--- a/_posts/2009-10-1-1-03100.md
+++ b/_posts/2009-10-1-1-03100.md
@@ -1,133 +1,133 @@
 ---
 layout: post
-title: 第三十一节 起威镖局
+title: "Section 31: The Qiwei Escort Agency"
 category: 1
 path: 2009-10-1-1-03100.md
 tag: [normal]
 ---
 
-　　“帮忙救票？”起威镖局的老掌柜孙可成眼睛转了几个圈，盯着来请他的孙常。
+"Help rescue a hostage?" The old master of the Qiwei Escort Agency, Sun Kecheng, narrowed his eyes, staring at Sun Chang who had come to request his help.
 
-　　孙常这孩子，论师传是他的师侄还和他有点瓜蔓亲，可是性子太直不受人待见。流落到广州之后干脆去当了人家的奴仆，他时常还觉得有些惋惜——可惜了他的功夫了。
+This young man, Sun Chang, was technically his martial nephew and a distant relative. However, his overly direct personality didn't win him many friends. After ending up in Guangzhou, he had become a servant, a fact Sun Kecheng often lamented—it was a waste of his martial arts skills.
 
-　　有心想在镖局里给他找口饭，奈何这些年镖行的市面不好，生意也大不如前。镖局不比其他的买卖，添人加口不过是多双筷子，镖局的买卖是一个萝卜一个坑，有生意才有人，生意多就添人，添人就得添开支，不会有很大的盈利。生意少不裁人，也得大家干得换稀得一起熬。生意不好，自然也没法加人。
+He had considered finding a position for him within the escort agency, but the business had been poor in recent years, much worse than before. An escort agency wasn't like other businesses where adding another person just meant adding another pair of chopsticks. In the escort trade, every man had a specific role. You only hired when business was good, and more men meant more expenses, leaving little room for profit. When business was slow, you couldn't just lay people off; everyone had to tighten their belts and endure together. With business being bad, there was no way to bring in new people.
 
-　　“是，我家老爷请您老人家过去商议。”
+"Yes, my master has invited you, old sir, to come and discuss the matter."
 
-　　孙可成有点模糊了，他记得孙常是在濠畔街那家大富商高举高老爷那里当差。这高老爷在广州城里也是手眼通天的人物，遭了匪不请官面上的人物，请他们做什么？
+Sun Kecheng was a bit puzzled. He remembered that Sun Chang worked for the wealthy merchant Gao Ju on Haopan Street. Master Gao was a man with connections all over Guangzhou. If he had trouble with bandits, why wouldn't he go to the officials? Why come to them?
 
-　　说到救票，镖局是不大感兴趣的。镖局和匪人的关系以和为贵，重“点春”，“交朋友”，不兴大砍大杀，你死我活。去救票就等于是狼口夺食——敢在这堂堂的一省省会绑票的匪人，不是一般的宵小之辈——动辄就是你死我活的一场恶斗，而且不管成功还是失败，只要介入之后露了身份，以后便和匪人结上了梁子。
+As for rescuing hostages, escort agencies were generally not interested. Their relationship with bandits was built on the principle of "harmony is precious." They focused on negotiation and "making friends," not on bloody, life-or-death confrontations. Rescuing a hostage was like snatching food from a wolf's mouth. Bandits who dared to pull off a kidnapping in a provincial capital were no ordinary thugs. It would inevitably lead to a vicious fight, and regardless of success or failure, once the agency's identity was revealed, they would have made a powerful enemy.
 
-　　但眼下局势不好。天启元年以来，各地乱相渐生，镖路愈来愈难走。收入日减。局里上上下下百十口人……
+But the current situation was dire. Since the first year of the Tianqi Emperor's reign, chaos had been spreading, and the escort routes were becoming increasingly dangerous. Their income was dwindling daily, and the agency had over a hundred mouths to feed...
 
-　　思来想去，最终还是答应了这桩买卖。一则这生意能让镖局的经济状况缓解大半，二则听这个师侄说，他的这家新主人是澳洲海商——这让孙掌柜起了兴趣——澳洲货最近声名鹊起。这伙海商不仅有钱而且待人宽厚，还特准他复还本姓，是仁义君子,于情于礼也得帮这个忙。
+After much thought, he finally agreed to take the job. For one, the payment would significantly alleviate the agency's financial strain. Secondly, his martial nephew had mentioned that his new masters were Australian sea merchants. This piqued Sun Kecheng's interest—Australian goods had recently become famous. These merchants were not only wealthy but also generous and had even allowed Sun Chang to use his original surname again. They were clearly men of honor and righteousness. Both for the sake of sentiment and propriety, he had to help.
 
-　　[萧子山][y001]和冉耀有点怀疑地看着这个孙常力荐的起威镖局的掌柜——他们原以为来得必是个彪形大汉，满脸胡须，类似武侠片里的人物，没想到来得居然是个半老头子，头戴缣巾，身着四跨衫，和街上走得老百姓没什么不同。走路虽还稳健，却看不出有武林英豪的模样。
+[Xiao Zishan][y001] and Ran Yao looked skeptically at the agency master Sun Chang had so highly recommended. They had expected a burly, bearded giant, someone out of a martial arts film. Instead, they saw a middle-aged man wearing a simple silk cap and a commoner's shirt, no different from any other old man on the street. Though his steps were steady, he showed no sign of being a martial arts hero.
 
-　　不过他们眼下急需人打听消息，高弟虽已经自告奋勇的出去了，但谁也不敢把希望都放在几个孩子的身上。当下一五一十把事情经过、踏勘结果都述说了一遍。
+However, they were in desperate need of someone to gather information. Although Gao Di had already volunteered and gone out, they couldn't pin all their hopes on a few children. They proceeded to explain the entire incident, including the results of their reconnaissance.
 
-　　听完了[萧子山][y001]的情况介绍和勘察的结论，孙可成点了点头：
+After listening to [Xiao Zishan][y001]'s account and the investigation's conclusions, Sun Kecheng nodded.
 
-　　“老爷们这里有高人啊。”
+"You have some very capable people here, masters."
 
-　　“我们人生地不熟，这城里的情形又不了解，还得拜托孙掌柜多多襄助了。”
+"We are strangers in a strange land and know nothing of the city's workings. We must rely on your assistance, Master Sun."
 
-　　“好说，好说，”孙可成笑着点点头，“孙常这孩子蒙你们高看。就凭这，起威镖局也得鼎力相助。”
+"Of course, of course," Sun Kecheng said with a smile and a nod. "You've shown great respect for my nephew, Sun Chang. For that alone, the Qiwei Escort Agency will give its full support."
 
-　　“那孙掌柜怎么看？”
+"Then what is your assessment, Master Sun?"
 
-　　“这位冉老爷不是说了么：有一人赤足。这广州城里，就算是四乡的乡民上城，再不济也得穿上双木屐草鞋的，不分时令一直赤足的，只有一种人——疍家。”
+"Didn't Master Ran here say it? One of them was barefoot. In Guangzhou, even villagers from the countryside wear at least wooden clogs or straw sandals when they come to the city. The only people who go barefoot year-round are the Dan people."
 
-　　“疍家？”[萧子山][y001]好像听说过这个说法，貌似是属于古代贱民的一种。
+"The Dan people?" [Xiao Zishan][y001] seemed to recall hearing the term before, apparently a class of outcasts in ancient times.
 
-　　“正是。老爷们不知道疍家？”孙可成解释道所谓疍家也称“蛋户”，是分布于闽粤桂三省沿海港湾和内河上的水上居民。“其遗民以舟揖为宅，捕鱼为业，辨水色则知有龙，昔时称为龙户，齐民则目为‘蛋家’”。
+"Precisely. You masters haven't heard of the Dan people?" Sun Kecheng explained that the Dan, also known as "boat households," were a population living on the water in boats along the coastal bays and inland rivers of Fujian, Guangdong, and Guangxi. "Their descendants live on boats, make a living by fishing, and can tell the presence of dragons by the color of the water. In ancient times they were called 'dragon households,' but the common people call them the 'Dan family'."
 
-　　“是渔民么？”
+"So they are fishermen?"
 
-　　孙可成道：“疍家虽在水上讨生活，有做渔民的。渔民却未必都是疍家。”他解释说但凡水上的各种生意，疍家都做，珠江上各个港湾岔口几乎到处有他们的船只。
+"While the Dan live on the water and some are fishermen, not all fishermen are Dan," Sun Kecheng clarified. He explained that the Dan were involved in all sorts of businesses on the water, and their boats could be found in almost every harbor and tributary of the Pearl River.
 
-　　绑匪中即有疍家人，这事情就明了多了。[文总][y002]很有可能是给藏在水上的某条船上，这里是南城，翻过城墙就是珠江。匪人只要一上船就海阔天空。而且疍家是非常封闭的社会群体，与陆上人有不同的方言习俗，不是熟悉他们就里的人，很难打听到消息。
+If there were Dan people among the kidnappers, the situation became much clearer. It was highly likely that [Director Wen][y002] was being held on a boat somewhere on the river. They were in the southern part of the city; just over the city wall was the Pearl River. Once the bandits were on a boat, the world was their oyster. Furthermore, the Dan were a very closed-off community with their own dialect and customs, different from those on land. It would be extremely difficult for an outsider to get any information from them.
 
-　　听到这里，大家不由得心都沉了下去。此事不妙啊。
+Hearing this, everyone's heart sank. This was not good.
 
-　　“这水上的船只没有上万，也得数千，就是排查也得个把月。”冉耀苦恼起来，忘记了在这个时空根本他根本没权力去排查。
+"There must be thousands, if not tens of thousands, of boats on this river. It would take a month just to search them all," Ran Yao said, frustrated, forgetting for a moment that in this time and place, he had no authority to conduct such a search.
 
-　　“老爷们不必沮丧。事情没那么难办。疍家虽和陆上人老死不相往来，彼此敌视，不过掳人绑票的事情，不会是他们主使。应是有外来的匪人勾结了花艇上的水上妓家。这种妓家常干些不法的勾当——那闷香就不是江湖上常见的东西，倒像是水上妓家盗人钱财所用。”
+"Don't be discouraged, masters. It's not as difficult as it seems. Although the Dan keep to themselves and are hostile towards land-dwellers, they wouldn't be the masterminds behind a kidnapping. It's more likely that outside bandits have colluded with the water-based brothels on the 'flower boats.' These establishments often engage in illicit activities. The incense used to knock out the victim isn't a common tool of the underworld, but it's often used by these water prostitutes to rob their clients."
 
-　　他胸有成竹的一笑：“[文老爷][y002]应该就在那些花艇上。”
+He smiled confidently. "[Master Wen][y002] should be on one of those flower boats."
 
-　　“花艇都泊在哪里？”
+"Where are the flower boats moored?"
 
-　　“疍家的花艇多半在拾翠洲的白鹅潭一带，在下回去就遣镖师出去打探。还有几件事情，在下可都诸位说明白了，切忌切忌。”
+"Most of the Dan's flower boats are in the White Goose Pool area near Shicui Isle. I'll send my men to investigate as soon as I get back. There are a few other things I must make clear to you all. You must not, under any circumstances, do them."
 
-　　第一是忌报官，虽然凭着高老爷的面子，一张帖子就能发动这广州一府二县的马步捕快，但这些人自己就是歹人，肥羊送上门来，不喂饱了银子是不会有什么动作的。搞不好还会和匪人勾结。
+First, do not report it to the officials. Although a word from Master Gao could mobilize the constables of the entire Guangzhou prefecture, these men were often corrupt themselves. When a fat sheep was delivered to their door, they wouldn't lift a finger without being well-fed with silver. They might even collude with the bandits.
 
-　　第二是不要抓捕送信的，这类人物不是临时街面上找来的乞丐，就是一般的混混，不会认识匪人，抓了不但无用而且容易引起对方警觉。
+Second, do not try to capture the messenger who delivers the ransom note. Such individuals are usually either beggars hired off the street or common thugs who don't know the bandits personally. Capturing them would be useless and would only alert the enemy.
 
-　　“最后便是不要轻举妄动，尊宅周围他们必有眼线。不过这些眼线也是找来的帮手，查问不出什么来的。”
+"Finally, do not act rashly. They will certainly have lookouts around your residence. However, these lookouts are also hired hands and won't know much if you question them."
 
-　　送走了孙掌柜，大家讨论这样坐等消息不是办法。好在对方即意在赎金，必然会有双方书信投送——这就是一条牵往绑匪的线索。在这大明广州城里搞跟踪虽然不行，现代技控技防却是没问题的。当下在院落各处都安装了摄像头，在院中架设了监控主机，由几组蓄电池供电。24小时不间断的监视周边。林深河沿路走了一圈，在前院屋顶上又安装了几个无线机位，用来监视街面。他自己套上一件迷彩套衫，带着望远镜、夜视镜、对讲机和步枪上了院中唯一的一棵大树，在枝杈密集间搭上一个铺，和北炜轮流值班，随时准备应变。
+After seeing Master Sun off, the group agreed that they couldn't just sit and wait. Since the kidnappers were after a ransom, there would inevitably be communication—a thread leading back to them. While modern tracking was impossible in Ming Dynasty Guangzhou, modern surveillance technology was not. They immediately installed cameras around the courtyard, setting up a monitoring station powered by several sets of batteries for 24-hour surveillance of the surroundings. Lin Shenhe took a walk around the area and installed several more wireless cameras on the roof of the front building to monitor the street. He then put on a camouflage suit, equipped himself with binoculars, a night-vision scope, a walkie-talkie, and a rifle, and climbed the only large tree in the courtyard. He set up a small platform among the dense branches, taking turns with Bei Wei to stand guard, ready to respond to any situation.
 
-　　冉耀则换上小厮的衣服，腰间带一个DV，由孙常引领着，在在濠畔街四下来来回回地走了一番。
+Ran Yao, dressed as a servant and carrying a concealed DV camera, was led by Sun Chang on a walk around Haopan Street.
 
-　　“找到盯梢的了！”回来他把DV往桌上一放，说。
+"I've found the lookouts!" he announced, placing the DV camera on the table upon his return.
 
-　　大家都精神一振，赶紧围拢过来。
+Everyone's spirits lifted, and they gathered around.
 
-　　“盯梢的一共四个人。”冉耀开着DV给大家看，“看这里，”他指着画面上的小贩，“心不在焉，眼睛一直在偷看高举家的宅门口。
+"There are four of them in total," Ran Yao said, playing the video for everyone to see. "Look here," he pointed to a street vendor on the screen. "He's distracted, constantly glancing at the entrance to Gao Ju's residence."
 
-　　“这个，虽然打扮成化子，却不在热闹的街上要饭，偏躲在高举家的角门的冷巷里。
+"This one, though dressed as a beggar, isn't begging on the busy street but is hiding in the quiet alley by Gao Ju's side gate."
 
-　　“这个是监视这里的大门。
+"This one is watching the main gate here."
 
-　　“还有这个——在茶馆里独自喝茶的，大约就是头子，他们可能还有一二个人作为机动，随时去报告消息。我们先把这些人的照片打印出来，人手一份。”
+"And this one—the man drinking tea alone in the teahouse—is probably their leader. They might have one or two others as mobile units to report back. We should print out photos of these men and give everyone a copy."
 
-　　“好！”
+"Good idea!"
 
-　　“要不要把他们抓来？”
+"Should we grab them?"
 
-　　“这些人多半都是外围分子，不一定熟悉情况。”
+"They're most likely peripheral members who don't know much."
 
-　　“要能跟踪就好了，那头子应该会和里面的首脑人物见面接触吧。”
+"If only we could tail them. The leader must meet with the masterminds at some point."
 
-　　“可能。可惜没法跟踪。”
+"Possibly. But we can't tail them."
 
-　　“想法在他身上放个无线信标如何？”
+"What if we plant a wireless beacon on him?"
 
-　　“那还不如直接把无线信标放在赎金里。就能直捣老巢了。”
+"We might as well put the beacon in the ransom money. That would lead us straight to their lair."
 
-　　“理论上可以。这里我们没有地图，也没有GPS，不能根据信号做精确定位。只能用无线电测向的方法来大概进行定位，地形太复杂了。”
+"Theoretically, yes. But we don't have a map or GPS here. We can't pinpoint their location based on the signal. We can only use radio direction finding to get a general idea, and the terrain is too complex."
 
-　　“关键是没有地图。”
+"The lack of a map is the key problem."
 
-　　“明朝应该有地图了吧？让人去买几张回来。”
+"Shouldn't there be maps in the Ming Dynasty? Have someone go buy a few."
 
-　　“孙常买回来一张了，但是这地图……实在没什么用。”明代的地图绘制方法还相当原始，现代制图术大致就是在这个时候由利玛窦传入中国的。
+"Sun Chang already bought one, but this map... it's practically useless." Ming Dynasty cartography was still quite primitive; modern mapping techniques were only just being introduced to China by missionaries like Matteo Ricci around this time.
 
-　　“不过这也是一个方案。谁懂无线电测向的？”
+"Still, it's a possible plan. Who here knows radio direction finding?"
 
-　　“我行。”北炜说。
+"I do," said Bei Wei.
 
-　　“那到时候就看你的了。”
+"Then we'll be counting on you when the time comes."
 
-　　“最好是能把地方打听出来，我们直接杀过去救人。”
+"It would be best if we could find out their location and just go in to rescue him."
 
-　　“问题不大，看那孙掌柜的意思，这几天就能找到下落似的。”
+"It shouldn't be a huge problem. From the way Master Sun spoke, it sounds like he expects to find him in a few days."
 
-　　“不知道[文总][y002]现在怎么样了。”
+"I wonder how [Director Wen][y002] is doing."
 
-　　孙掌柜回到镖局，喝了几壶酽酽的浓茶，想了半晌。他在澳洲海商那里拍了胸脯，心里已经有了七八分底气。有水上妓家搀和这已经是肯定的事情，即使那澳洲的冉捕快不说有赤足脚印的事情，在屋子里嗅到的味道也告诉了他这一点。但是如何去查却有点费思量——镖局的规矩是不能踏足妓院花船这样的风月之地。对里面的人头并不熟悉。
+Back at his agency, Master Sun drank several pots of strong tea and thought for a long while. He had confidently beaten his chest at the Australian merchants' place, already feeling seventy to eighty percent sure of his plan. The involvement of the water brothels was a certainty; even if the Australian "Constable Ran" hadn't mentioned the barefoot tracks, the smell in the room would have told him as much. But how to investigate was a tricky matter—the agency's code forbade them from setting foot in places of pleasure like brothels and flower boats. They weren't familiar with the people there.
 
-　　好在花艇的食用供给，还是需要仰仗陆地上的商贩。从那些专做花艇买卖的小商贩嘴里，肯定能知道点什么。别得不说，艇上多一个人出来，伙食就会增加不少。
+Fortunately, the flower boats still relied on merchants from the land for their food and supplies. He could surely learn something from the small vendors who specialized in serving the flower boats. If nothing else, an extra person on a boat would mean a noticeable increase in food consumption.
 
-　　当下叫了几个镖师过来，分成两拨，一拨扮成游商，去暗访，另外一拨则找相熟的商贩打听。如此的吩咐了一番，又嘱咐道：
+He summoned several of his best men and divided them into two groups. One group would pose as itinerant merchants to investigate covertly, while the other would ask around with familiar vendors. He gave them their instructions, adding a final reminder:
 
-　　“你们要注意打听最近有没有什么艇有了包船的客人，或是哪艘艇突然不接客了。”
+"Pay attention and find out if any boat has recently been chartered by a single client, or if any boat has suddenly stopped taking customers."
 
-　　花艇上面积甚小，是不可能边藏票边接客的。
+The flower boats were small. It was impossible to hide a hostage and continue business as usual.
 
-　　只要查清了藏票的地点，救票就不是什么难事。孙掌柜过去为几家老客做过救票的事情，他知道绑匪不大会和肉票在一起，看票的多半是些小喽罗，这一是怕在票面前露了相，二来怕藏票的地方万一被官府破获，自己不会跟着玉石俱焚。
+Once they located the hiding spot, the rescue would not be difficult. Master Sun had rescued hostages for several old clients before. He knew that the kidnappers rarely stayed with the hostage. The guards were usually just low-level thugs. This was partly to avoid being identified by the victim and partly to ensure that if the location was raided by officials, the leaders wouldn't be caught along with everyone else.
 
-　　不过那冉捕快也说了：镖局的主要活计是打听消息，至于最后怎么做，由他们决定。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+However, Constable Ran had also made it clear: the agency's main job was to gather intelligence. The final course of action would be decided by them.
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
