--- a/_posts/2009-10-11-1-04100.md
+++ b/_posts/2009-10-11-1-04100.md
@@ -1,110 +1,112 @@
 ---
 layout: post
-title: 第四十一节 船只（一）
+title: "Section 41: The Ship (Part 1)"
 category: 1
 path: 2009-10-11-1-04100.md
 tag: [normal]
 ---
 
-　　这几天郭逸到处奔走，他知道的越多，了解的反而越少。
+For the past few days, Guo Yi had been running around everywhere. The more he knew, the less he understood.
 
-　　本来以为只是短暂的出差二、三天的事情，现在他向领导汇报说要多呆些日子，从电话中的语气里，郭逸知道领导认为自己有点多事，或者觉得他是想借机游山玩水，但是事情的发展已经变得让他越来越有兴趣。
+He had originally thought it would be a short business trip of two or three days. Now, he had reported to his superior that he needed to stay longer. From the tone of the voice on the phone, Guo Yi knew his leader thought he was being meddlesome, or perhaps just using the opportunity for a vacation. But the developing situation had become more and more interesting to him.
 
-　　首先他发现几乎每天都有人到来，来得人不多，但是南腔北调，多数很年轻，基本为男性。而且不是这一带常见的劳动密集型企业的打工者，个个都带有大量的行李。
+First, he discovered that people were arriving almost every day. Not many, but they came from all over the country, speaking different dialects. Most were young, and almost all were male. They were not the typical migrant workers seen in the labor-intensive enterprises of this area; each of them carried a large amount of luggage.
 
-　　其次，在走访该公司联系过的本地企业的过程中，他又发现了一个不同寻常的地方。
+Second, in the process of visiting the local enterprises that the company had contacted, he discovered another unusual thing.
 
-　　本市周边一带的各类专业批发市场，在近三个月的时间里部分商品的销售量暴涨，初步汇总起来看增幅明显的东西有：各种食品、医具药品、工具、水泵、电动机、小型动力机具、各种规格的优质碳钢、合金钢材料和电解铜等金属原料、测量仪器仪表、成衣鞋袜等等。
+In the various professional wholesale markets around the city, the sales volume of certain commodities had skyrocketed over the past three months. A preliminary summary showed significant increases in: various foods, medical equipment and drugs, tools, water pumps, electric motors, small power machinery, various specifications of high-quality carbon steel, alloy steel materials, electrolytic copper and other metal raw materials, measuring instruments, ready-made clothes, shoes, and socks, and so on.
 
-　　联想到穿越公司的全国性采购，郭逸毫不犹豫的认定，这些采购应该也是穿越公司的。显然他们把采购分为二个部分，普通的，简单的物品从当地采购；技术含量比较高，或者地区差价明显的，则从外地直接采购。
+Connecting this to Transmigration Trading's nationwide procurement, Guo Yi had no doubt that these purchases were also made by them. It was clear they had divided their procurement into two parts: ordinary, simple items were sourced locally, while items with higher technical content or significant regional price differences were purchased directly from other parts of the country.
 
-　　郭逸已经懒得假设他们打算做什么，他决定，直接去那公司看看。
+Guo Yi couldn't be bothered to guess what they were planning to do anymore. He decided to go directly to the company and see for himself.
 
-　　打了个摩的去了基地，训练基地看起来相当的老旧，多半还是六七十年代的建筑，中间一栋办公楼稍微新一点，也有十多年的历史了。没看出该公司搞过什么建设，虽然他查到穿越公司买了了不少工程机械。基地的大门敞开着，门房里有两个老头在聊天抽烟，看起来真是要多正常就有多正常。郭逸担心亮出证件直接进去会打草惊蛇。便爬上了周边的一座小山，用望远镜观察了一会。
+He took a motorcycle taxi to the base. The training base looked quite old, mostly built in the 60s and 70s. An office building in the middle was slightly newer but was still over a decade old. He saw no signs of any new construction by the company, even though he had found that Transmigration Trading had purchased a lot of construction machinery. The main gate of the base was wide open. In the gatehouse, two old men were chatting and smoking. Everything looked as normal as could be. Guo Yi worried that flashing his credentials and going in directly would alert them. So, he climbed a small hill nearby and observed with his binoculars for a while.
 
-　　操场上，可以看到穿着草绿色作训服的队伍，分成几批在做队列训练。他的镜头忽然顿住了，清清楚楚地看到，有几排队列手里都拿着短竹竿，还有人挎着军鼓，虽然距离远并不能听见声音，这些人显然是在按鼓点的节奏在行进，一会队列展开成横队，一会成纵队，忽然又变成方队。接着，前排的人又半蹲着竹竿斜刺向上，后面的人则站着竹竿平举，摆出一幅奇怪的姿势来。
+On the training ground, he could see teams in grass-green training uniforms, divided into several groups, conducting drills. His lens suddenly stopped. He could clearly see that several rows of people were holding short bamboo poles. Some had military drums slung over their shoulders. Although he was too far away to hear the sound, it was obvious they were marching to the rhythm of the drums. The formation would expand into a line, then a column, and then suddenly a square. Then, the front row would half-squat, pointing their bamboo poles diagonally upwards, while the people behind them stood and held their poles level, forming a strange posture.
 
-　　这是在干什么？郭逸自己高中、大学还有入职的时候都军训过，记忆里队列训练的内容从来也不曾有这些。
+What were they doing? Guo Yi had undergone military training in high school, university, and when he started his job, but he had never seen these drills before.
 
-　　郭逸拼命的调节焦距，看到这些人接着做出一整套动作来：摆弄竹竿，从胸口摸出什么来，放到嘴边做咬状，然后在竹竿顶端摆弄一番……他越看越迷糊——这些人除了竹竿之外，手里什么都没有啊？
+Guo Yi desperately adjusted the focus. He saw them perform a whole set of movements: handling the bamboo poles, taking something from their chests, bringing it to their mouths as if biting it, and then fiddling with the top of the pole... The more he watched, the more confused he became—these people had nothing in their hands but the bamboo poles.
 
-　　“怪事。”他嘟哝了一句，看不透这些鬼画符式的动作到底是什么用意。便把望远镜移到其他地方，沙坑旁，有一群人正在练习徒手搏击，当中的那个教员模样的人，显然是野战部队出身——郭逸的单位里有不少转业军人。职业军人的那种千锤百炼的身板气概，距离很远也能感受得到。
+"Strange," he muttered, unable to comprehend the meaning behind these bizarre, ritualistic movements. He moved his binoculars to other areas. By the sandpit, a group of people was practicing unarmed combat. The instructor-like figure in the middle was clearly from a field army unit—Guo Yi had many demobilized soldiers in his own department. The honed physique and aura of a professional soldier were palpable even from a distance.
 
-　　焦距调整到最大，看到码头上堆了许多铁桶和角钢之类的东西，有些人正在焊接什么，火花四射。码头上还有二艘搁在艇架上的小划艇。
+He adjusted the focus to its maximum. On the pier, he saw many iron barrels and angle steel piled up. Some people were welding something, sparks flying. There were also two small rowboats on cradles on the pier.
 
-　　“这公司，到底在搞什么妖蛾子……”
+"What on earth is this company up to..."
 
-　　郭逸在转悠了大半天，终于失望的回到了市里，除了越来越大的疑团，什么也没得到。
+Guo Yi wandered around for most of the day and finally returned to the city in disappointment. He had gained nothing but a growing pile of questions.
 
-　　这天晚上，郭逸从酒店出来，在街上转了转，找了个小馆子喝了二瓶啤酒。心里郁闷透了。他从来不怀疑自己的智商，工作这些年来也经历过不少事情，一般的事，到他手里用不了多久就能估摸个七七八八。但是眼前这件事情，却让他至今尤在迷雾中。
+That night, Guo Yi left the hotel and wandered the streets, finding a small restaurant where he drank two bottles of beer. He was thoroughly frustrated. He had never doubted his intelligence, and he had handled many cases over the years. Usually, he could get a good grasp of a situation in a short time. But this time, he was still completely in the dark.
 
-　　“还是先回去吧。”郭逸想，在这里窝着也不是事情。前前后后已经四天了，调查不能无休止的进行下去。从掌握的材料来看，这个公司是有点可疑，但没干什么有碍社会安定团结的事情，它采购那么多的东西是它的自由，至于是洗钱还是其他什么问题，就让相关部门来过问好了。
+"I should just go back," Guo Yi thought. Hiding out here wasn't a solution. It had been four days already, and the investigation couldn't go on indefinitely. From the information he had gathered, this company was a bit suspicious, but they hadn't done anything to disrupt social stability. Their massive purchases were their own business. Whether it was money laundering or some other issue, he could let the relevant departments handle it.
 
-　　郭逸的调查，通过钟利时和几位当地人士的社交活动，多多少少传到执委会的耳中。不过，消息能透出来本身就说明谁也没拿这事当回事。[萧子山][y001]多少有些担心，事情进行到这一步已经是临门一脚了，谁也不希望和男足一样的结果。早晨他去食堂吃过饭，急急忙忙的找[文德嗣][y002]。
+***
 
-　　“我觉得没什么。”[文德嗣][y002]考虑了一下说，“让他尽管去查就是，我们没干什么犯禁的事情。他查不出问题。”
+News of Guo Yi's investigation, through Zhong Lishi's and other local contacts' social activities, had more or less reached the ears of the Executive Committee. However, the fact that the news could leak out at all showed that no one was taking it too seriously. [Xiao Zishan][y001] was somewhat worried. They were at the final step, and no one wanted a last-minute failure. In the morning, after breakfast at the cafeteria, he hurried to find [Wen Desi][y002].
 
-　　“还是抓紧吧，夜长梦多。”
+"I don't think it's a big deal," [Wen Desi][y002] said after some consideration. "Let him investigate all he wants. We haven't done anything illegal. He won't find anything."
 
-　　“预计报到的人都确认好了吗？”
+"We should still hurry. Delays can bring trouble."
 
-　　“都确认过了，还有19个在下周四之前全部到齐。不参加的我也都确认了。”
+"Have all the expected arrivals been confirmed?"
 
-　　“那我们下周五就开全体大会。”
+"All confirmed. There are still 19 people who will all arrive by next Thursday. I've also confirmed with those who are not coming."
 
-　　“相关的提案都准备好了吗？”
+"Then we will hold the general assembly next Friday."
 
-　　“这几天各个小组都在讨论和提各种建议，大家情绪还是比较高涨的。”
+"Are all the relevant proposals ready?"
 
-　　正在说话，办公室的门推开了，风尘仆仆的[王洛宾][y003]走了进来。他在执委会中目前担任的是物资准备的立项、审批和采购工作。经常在各地奔波。最近三个月，他集中力量在搞船的问题上。
+"The various groups have been discussing and putting forward suggestions these past few days. Everyone's morale is quite high."
 
-　　穿越者们在穿越贸易中发现：虫洞的能量是随着打开的时间流逝而逐步衰减的，虫洞打开的时间越长，虫洞消耗的能量愈多。
+As they were talking, the office door opened, and a travel-worn [Wang Luobin][y003] walked in. He was currently in charge of project initiation, approval, and procurement of materials for the Executive Committee. He was often traveling. For the past three months, he had been concentrating his efforts on the problem of the ship.
 
-　　小型的穿越贸易，涉及到的东西最多也不过是几拖车而已。当总得穿越行动开始之后，则几千吨物质要通过虫洞——使用汽车队输送物资和人员的方案显然是行不通的——穿越时间太过漫长，很可能没有完全运送完毕就会耗尽最后的能量。
+During their trade missions, the transmigrators had discovered that the wormhole's energy decayed over time as it was kept open. The longer the wormhole was open, the more energy it consumed.
 
-　　唯一能够在较短的时间通过虫洞，又能够运输大量物质的，只有船只了——尽可能大的船只。穿越众的采购清单越来越膨胀，没有一艘大船，无论如何也不可能把几百个活人和几千吨的设备物资一下子送到17世纪去的。
+A small-scale trade mission involved at most a few truckloads of goods. But when the main transmigration began, thousands of tons of materials would have to pass through the wormhole. The plan to use a fleet of trucks to transport materials and personnel was clearly not feasible—the transit time would be too long, and they would likely run out of energy before everything was transported.
 
-　　除了运输本身，一艘现代货船就是一个现代工业社会的缩影，各种主机副机、高低压管道、帮浦、电缆、电子通讯和观测设备、制淡设备、小型机修车间、卫生所……有了一艘船，在陆地基地没有建设起来之前，就是一个完整的现代世界，穿越者可以在这个现代基地里获得电力和加工设备上的支持。最大的好处是它能在相当时间内维持住基本的现代生活条件，免得这些享受惯的了现代人猝然感到生活条件太艰苦而精神崩溃。
+The only way to transport a large amount of material through the wormhole in a relatively short time was by ship—the largest ship possible. The transmigrators' procurement list was ever-expanding. Without a large ship, it would be impossible to send several hundred living people and thousands of tons of equipment and materials to the 17th century all at once.
 
-　　最后是可观的军事作用。巨大铁船足以形成震撼人心的压迫感，钢铁的身躯不惧怕任何炮弹和纵火武器。就算勇敢者想跳帮白刃，也得爬得上那高耸如城墙的干舷。
+Besides transportation, a modern cargo ship was a microcosm of a modern industrial society, with main and auxiliary engines, high and low-pressure pipelines, pumps, cables, electronic communication and observation equipment, desalination equipment, a small machine repair shop, a clinic... With a ship, they would have a complete modern world before the land base was built, providing power and processing equipment support. The biggest benefit was that it could maintain basic modern living conditions for a considerable time, preventing these people, accustomed to modern comforts, from having a mental breakdown due to the sudden hardship.
 
-　　无需装备任何武器，就是开足马力直撞过去也足够让那个时空任何战舰都要失魂落魄——小一点的船直接浪沉，大船也经不起钢铁船首的一撞，他们还无路可逃，即使很老的旧船，也能轻轻松松达到11－14节的航速，除了某些快帆船在有利的风向下也许能逃出魔掌，绝大多数船只能任其蹂躏。
+Finally, there was its considerable military value. A giant iron ship would be enough to create a shocking sense of oppression. Its steel body feared no cannonballs or incendiary weapons. Even if brave men wanted to board for close combat, they would have to climb the towering freeboard, which was like a city wall.
 
-　　华丽的多炮塔战列货船！有这么一艘船，岂不是就是海洋的主人。
+Without any weapons, just ramming at full speed would be enough to make any warship of that era lose its nerve. Smaller ships would be sunk by its wake, and larger ships could not withstand a collision with its steel bow. They would have no way to escape. Even a very old ship could easily reach speeds of 11-14 knots. Except for certain fast sailing ships with favorable winds, most ships could only be ravaged at will.
 
-　　华丽的梦境背后往往伴随着可怕的现实，带来现实的是一位海事大学的毕业生。
+A magnificent multi-turreted battle-freighter! With such a ship, wouldn't they be the masters of the ocean?
 
-　　正在这时候，蒙德出现了。
+But behind the glorious dream often lies a terrible reality. The reality was brought by a graduate of a maritime university.
 
-　　蒙德知道聊天群已经是第二批骨干人员报到之后的事情。在经常出没的BBS上偶然获时空穿梭门居然真的出现了，而且已经开始暗中召集同党去崇祯初年改变历史。确认了消息的真实性后，蒙德毅然决定加入其中，梦想成为一个真正的历史篡改者。
+It was at this time that Meng De appeared.
 
-　　他是这伙穿越众中唯一一个海事大学的毕业生，并且工作内容经常接触船舶。
+Meng De only found out about the chat group after the second batch of core personnel had already reported. He had stumbled upon the news that a real time-travel portal had appeared on a BBS he frequented, and that they were secretly recruiting comrades to go back to the early Chongzhen era to change history. After confirming the authenticity of the news, Meng De resolutely decided to join, dreaming of becoming a true history-altering figure.
 
-　　他在的学历和工作经历立刻引起了执委会的注意，虽然执委会觉得此人的操船技能有二把刀的嫌疑，但是除他之外也没有什么人懂大型货轮了。
+He was the only graduate of a maritime university among the transmigrators, and his work often involved ships.
 
-　　海事大学和虫洞能量两个毫不相干的因素，注定了他将是在穿越历史上单独留下章节的人之一。
+His education and work experience immediately caught the attention of the Executive Committee. Although the committee suspected his ship-handling skills might be half-baked, there was no one else who understood large cargo ships.
 
-　　在特意召开的一次船只问题会议上，他被聘请当了顾问。这让这个毕业才不过几年的小伙子第一次感到自己备受重视。
+The maritime university and the wormhole's energy, two completely unrelated factors, destined him to be one of the people who would leave a separate chapter in the history of the transmigration.
 
-　　“[文总][y002]，这事情不好办，”蒙德听完了执委会的计划介绍，“船员，我们没有船员。”
+At a special meeting convened to discuss the ship problem, he was hired as a consultant. This made the young man, who had graduated only a few years ago, feel highly valued for the first time.
 
-　　“需要多少人？”
+"[Director Wen][y002], this is not going to be easy," Meng De said after listening to the Executive Committee's plan. "The crew. We don't have a crew."
 
-　　“比较旧的船5000吨以下一般是40人，上到万吨的都在50人以上。”蒙德说，“新的使用无人机舱的船也在20人以上。”他摊开了手，“这些人都是技术性工种，穿越众不可能胜任。”
+"How many people are needed?"
 
-　　中国的商船如果不运客，基本都分甲板部和轮机部两大部分。仅甲板部就有船长、大二三副、主任报务员、报务员、货运员、理货员、水手长、副水手长、一水、二水、大厨、二厨、三厨，舱面服务员等。
+"For an older ship under 5,000 tons, it's generally 40 people. For one up to 10,000 tons, it's over 50," Meng De said. "Even a new ship with an unmanned engine room needs more than 20." He spread his hands. "These are all technical positions. The transmigrators can't do it."
 
-　　关键的轮机部则有：轮机长、大二三管轮、电机员、机匠长、生火长、机匠、副机匠、铜匠、电匠、加油、生火等等。
+A Chinese merchant ship, if not carrying passengers, is basically divided into two main departments: deck and engine. The deck department alone has a captain, chief, second, and third mates, chief radio officer, radio officers, cargo officers, tallymen, boatswain, assistant boatswain, able seamen, ordinary seamen, chief cook, second cook, third cook, and deck service staff.
 
-　　“如果我们要长期运用这艘船的，这些人即使不全配上，也得有一半人。特别是轮机部门。”
+The crucial engine department has: chief engineer, second, third, and fourth engineers, electrician, chief mechanic, chief fireman, mechanics, assistant mechanics, coppersmith, electrician, oilers, firemen, and so on.
 
-　　执委会面面相觑，一条船这么复杂？那还搞个P啊。有这么一个海运专业人员来参加已经是运气很好了，还指望来一船水手？
+"If we want to operate this ship long-term, even if we don't have a full crew, we need at least half of them, especially for the engine department."
 
-　　“如果只是穿越过去呢？”
+The Executive Committee members looked at each other. A ship was this complicated? Then what was the point? It was already a stroke of luck to have one maritime professional join; how could they hope for a whole crew of sailors?
 
-　　“也有很大难度。虽然可以再少一些人。”蒙德提出了他的建议：在雷州半岛某港口设立一个货代处，租用仓库。所需要的各种物资，一并运至该港待装货；租用或者买一条沿海散货船，航运目的地设定为海南的博铺港，一部分穿越众可以伪装成背包客搭船，这在沿海货轮是常见现象，其他人则搭乘几艘渔船先行抵达会合点。船出海航行至接近港口时，穿越众接管轮船，将船员赶下海，自驾船舶穿越时空门，然后在海南岛坐滩。
+"What if it's just for the one-way trip?"
 
-　　“琼州海峡非常狭窄，我个人以为我自己的操船能力还可以做到。轮机和基本舱面人员，建议执委会派出一些人去学习下，但是这船以后就基本上用不了了。”
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
+"That's also very difficult, although we could do with fewer people." Meng De proposed his suggestion: set up a freight forwarding office at a port on the Leizhou Peninsula and rent a warehouse. All the necessary materials would be transported to that port to await loading. They would rent or buy a coastal bulk carrier, with the destination set as Bopu Port in Hainan. Some transmigrators could pose as backpackers and hitch a ride, a common phenomenon on coastal freighters. The others would take several fishing boats to the rendezvous point first. When the ship was at sea and approaching the port, the transmigrators would take over the ship, force the crew off, and pilot the ship through the time gate themselves, then run it aground on Hainan Island.
+
+"The Qiongzhou Strait is very narrow. I personally think my ship-handling skills are up to the task. As for the engine and basic deck crew, I suggest the Executive Committee send some people to get some training. But the ship will be basically unusable after that."
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
