--- a/_posts/2009-10-12-1-04200.md
+++ b/_posts/2009-10-12-1-04200.md
@@ -1,115 +1,107 @@
 ---
 layout: post
-title: 第四十二节 船只（二）
+title: "Section 42: The Ship (Part 2)"
 category: 1
 path: 2009-10-12-1-04200.md
 tag: [normal]
 ---
 
-　　“用不上了？！”不少人面露失望之色。华丽的铁甲多炮塔铁甲战列货船就这么烟消云散了？
+"Unusable?!" Many faces showed disappointment. The magnificent, multi-turreted ironclad battle-freighter had vanished into thin air just like that?
 
-　　“为什么要坐滩呢？”有人提出异议，“船一旦坐滩搁浅之后，再浮起来不就很难了吗？现在是没有足够的船员，暂时开不动，不等于以后不能用么。”
+"Why do we have to run it aground?" someone objected. "Once a ship is beached and grounded, isn't it very difficult to refloat it? We may not have enough crew now, and can't operate it for the time being, but that doesn't mean we can't use it in the future."
 
-　　“就穿一下，然后就当旅馆用？太浪费了！我等穿越众没有无敌战船，如何和海盗浪战？”
+"Just to transmigrate once, and then use it as a hotel? What a waste! Without an invincible warship, how can we, the transmigrators, fight pirates on the waves?"
 
-　　“有了这船，什么郑芝龙，刘香、荷兰、英国，统统都是渣！”
+"With this ship, what are Zheng Zhilong, Liu Xiang, the Dutch, the English? They're all nothing!"
 
-　　“能不坐滩么？”[文德嗣][y002]问道，“海南西部有不少良港的，光临高就有好几个深水港开发区。是叫金牌港吧？还在广州搞过招商。那里应该有足够多的深水泊位。”
+"Can we avoid beaching it?" [Wen Desi][y002] asked. "There are many good harbors in western Hainan. Lingao alone has several deep-water port development zones. Is it called Jinpai Port? They even held an investment promotion event for it in Guangzhou. There should be enough deep-water berths there."
 
-　　“没那么简单。”
+"It's not that simple."
 
-　　蒙德知道大伙对海运、港口设施的了解基本上都是空白，对此先稍做了解释
+Meng De knew that everyone's understanding of shipping and port facilities was basically a blank slate, so he first gave a brief explanation.
 
-　　近代以前，除了极少数地理水文条件特别优越的港口，大型船舶能够直接靠泊岸边之外，世界上多数的港口，大船都得下锚在港内水较深的地方，再用趸船和小艇逐一将船上的货物和旅客转运到岸上。一直到近代，许多大型港口内还要专门配备供旅客上下大型邮轮的港内渡船和货物趸船。这样的效率当然很低。所以现代港口内要修筑各式各样的码头配套设施，即使是最简单的配备，也得有几条栈桥。
+Before modern times, with the exception of a very few ports with particularly favorable geographical and hydrological conditions where large ships could dock directly, in most ports around the world, large ships had to anchor in deeper water within the harbor and then use lighters and small boats to transfer cargo and passengers to the shore. Even in the modern era, many large ports still have to equip special harbor ferries and cargo lighters for passengers to board and disembark from large cruise ships. This process was, of course, very inefficient. That's why modern ports have to build all sorts of supporting pier facilities. Even the simplest setup requires at least a few jetties.
 
-　　穿越众打算登陆的临高，处于海南岛的北部地区，琼北地区的港口，东起木栏头，西至兵马角，沿岸有一系列向内陆凹入的港湾岸段落，自东向西有铺前湾、海口湾、澄迈湾、东水港、花场港、马袅港、红牌港以及后水湾。
+The transmigrators planned to land in Lingao, located in the northern part of Hainan Island. The ports in northern Qiongzhou, from Mulan Head in the east to Bingma Point in the west, have a series of bays indented into the mainland. From east to west, there are Puqian Bay, Haikou Bay, Chengmai Bay, Dongshui Port, Huachang Port, Ma'niao Port, Hongpai Port, and Houshui Bay.
 
-　　沿着这些海湾，大大小小的港口不计其数。但是多半属于小型的天然港口，只有些渔船停泊，明代海南岛虽是中外海上贸易的重要中途站，许多商船都会在这里停靠避风和补充食水，但是本身的海贸却并不发达，而且主要集中在琼山的神应港。临高境内各港湾几乎都保留着原始的面貌。
+Along these bays, there were countless ports of all sizes. But most were small natural harbors where only fishing boats moored. Although Hainan Island in the Ming Dynasty was an important stopover for maritime trade between China and foreign countries, and many merchant ships would stop here for shelter and to replenish food and water, its own maritime trade was not developed and was mainly concentrated in Shenying Port in Qiongshan. The various bays in Lingao were almost all in their original, undeveloped state.
 
-　　“明代的这些海南港湾里不会有什么港口设施。而且琼北地区的港口，水深普遍不大。[文总][y002]说的金牌港开发区，实际就是红牌港，该港港区经过一期的开发疏浚，也刚刚形成5000吨杂货轮的停泊能力。”
+"There won't be any port facilities in these Hainan bays in the Ming Dynasty. And the ports in the northern Qiongzhou region are generally not very deep. The Jinpai Port development zone that [Director Wen][y002] mentioned is actually Hongpai Port. After the first phase of development and dredging, that port area has just reached the capacity to berth 5,000-ton general cargo ships."
 
-　　这番话引起了大家的窃窃私语，许多人一直以为红牌是个天然良港。事实却并非如此。红牌半岛向北突出在开阔海域，岬角岸段常年受到风浪的强烈侵蚀，形成浪蚀陡崖和海蚀平台。被侵蚀的熔岩碎屑随波流运移到半岛西侧堆积，形成一片砾滩，而比较细的泥沙则向红牌港内运移，湾内成为中、粗砂堆积的滩地。半岛西侧的红牌屿是玄武岩海蚀平台，其前缘海域水深条件较好，多为5米以深的海域。而红牌港港内的受到沿岸漂沙淤浅，水深只有2－4米了。
+This statement caused a stir of whispers. Many had always thought Hongpai was a good natural harbor, but the reality was different. The Hongpai Peninsula juts north into the open sea, and its cape is constantly eroded by strong waves, forming wave-cut cliffs and platforms. The eroded lava debris is carried by currents and deposited on the west side of the peninsula, forming a gravel beach, while the finer silt and sand are transported into Hongpai Port, turning the bay into a shoal of medium and coarse sand. The Hongpai Islet on the west side of the peninsula is a basalt sea-erosion platform, and the sea in front of it has better depth, mostly over 5 meters. But inside Hongpai Port, due to siltation from coastal drift, the water depth is only 2-4 meters.
 
-　　本来执委会计划选择金牌港（即红牌港）作为船只停泊的港口，蒙德的这番话完全打消了他们的计划。2－4米的水深条件，别说万吨轮，二三千吨的船都很困难。
+The Executive Committee had originally planned to choose Jinpai Port (i.e., Hongpai Port) as the berthing port for the ship. Meng De's words completely shattered their plan. With a water depth of 2-4 meters, let alone a 10,000-ton ship, even a 2,000-3,000-ton ship would have difficulty.
 
-　　“而且港内形成的大量滩地，将使我们的卸货工作变得很困难。”
+"And the large number of shoals that have formed in the port will make our unloading work very difficult."
 
-　　“在临高的这些港口，水文条件最好的是后水湾地区。在湾内邻昌岛东西两侧都有10米水深的深槽向湾内延伸，该岛南部的波影区为泥沙堆积的浅滩，水深仍有7－8米深。沿岸都是珊瑚岸礁，抗侵蚀能力强，海湾内的泥沙来源较少，岸滩的冲淤已趋向稳定状态。应该说后水湾地区是临高最好的天然深水港。对穿越者来说，后水湾有邻昌岛作为天然的港口屏障，在上面建造炮台可以有效的对海面攻击进行防御，比红牌屿这样的小礁屿要强得多。”
+"Among the ports in Lingao, the one with the best hydrological conditions is the Houshui Bay area. On both the east and west sides of Linchan Island within the bay, there are deep troughs of 10 meters extending into the bay. The shadow area south of the island is a shoal of silt and sand, but the water depth is still 7-8 meters. The coast is lined with coral reefs, which are resistant to erosion, so there is less sediment source within the bay, and the coastal erosion and deposition have stabilized. It should be said that Houshui Bay is the best natural deep-water port in Lingao. For the transmigrators, Houshui Bay has Linchan Island as a natural harbor barrier. Building a fort on it can effectively defend against sea attacks, much better than a small reef like Hongpai Islet."
 
-　　什么是专业，这就是专业！不管是优秀的军队组织还是高效率的社会生产组织，合理分工——在工作岗位配制专业化的人员都是基础和前提。执委会深刻的体会到了这一点。会议室里有一种肃然起敬的气氛。
+What is professionalism? This is professionalism! Whether it's an excellent military organization or a highly efficient social production organization, a rational division of labor—placing specialized personnel in their respective work positions—is the foundation and prerequisite. The Executive Committee deeply understood this point. An atmosphere of solemn respect filled the conference room.
 
-　　“看来这个世界上的事情不能想当然啊！”[马千瞩][y005]发出感慨。
+"It seems we can't take things for granted in this world!" [Ma Qianzhu][y005] exclaimed.
 
-　　“我们把港口基地选在后水湾？既然此地的条件优越。”
+"Should we choose Houshui Bay as our port base? Since the conditions there are superior."
 
-　　“不，不行，”蒙德连连摇头，“后水湾作为港口很好，作为登陆基地条件不合适——没有水。”
+"No, we can't," Meng De shook his head repeatedly. "Houshui Bay is excellent as a port, but it's not suitable as a landing base—there's no water."
 
-　　临高的后水湾地区在古代没有较大的天然河流，是县内比较干旱的地区，该地区附近的村落长期受缺水的困扰，一直到解放后，才打了深水井，开凿了多条灌溉渠道，解决了该地的缺水问题。
+In ancient times, the Houshui Bay area of Lingao had no large natural rivers and was a relatively arid region of the county. The nearby villages had long suffered from water shortages. It wasn't until after the Liberation that deep wells were drilled and multiple irrigation channels were dug to solve the water problem.
 
-　　没有足够的淡水，做什么都很不方便。而且这个地方离临高县城和未来穿越者的主地基也都嫌远了点。联络运输起来不大方便。
+Without sufficient fresh water, everything would be very inconvenient. Moreover, this place was a bit too far from both Lingao County town and the transmigrators' future main base. Communication and transportation would be inconvenient.
 
-　　“那你的建议呢？”此刻的询问的语气已经从随意变得尊重起来。
+"Then what is your recommendation?" The tone of the inquiry had now changed from casual to respectful.
 
-　　“未来的主基地设在哪？”
+"Where will the future main base be located?"
 
-　　“百仞滩。在文澜江的下游地区。”
+"Bairen Tan. In the lower reaches of the Wenlan River."
 
-　　“想要最近的话就是博铺港好了。”蒙德想了想，“博铺港实际就是文澜江的河口，在港口分类上是河口港，这里长期是海南岛和大陆进出的要津，也是天然的避风港。该港的中心深水槽的能有6－7米深，但是港内沙洲纵横，锚地很小。”
+"If you want the closest option, then Bopu Port is the one." Meng De thought for a moment. "Bopu Port is actually the estuary of the Wenlan River. In port classification, it's an estuary port. It has long been a key point of entry and exit between Hainan Island and the mainland, and it's also a natural typhoon shelter. The central deep-water channel of the port can be 6-7 meters deep, but the harbor is full of sandbars, and the anchorage is very small."
 
-　　“这个深度足够万吨轮了吧？我记得吃水7米左右。”
+"That depth should be enough for a 10,000-ton ship, right? I remember their draft is around 7 meters."
 
-　　“没错，如果是浅吃水型沿海杂货轮还能更浅一点。问题是我没有当地水文资料——不对，是没有明代的水文资料。而且即没有引水员，轮机人员再是凑合的话，就算是现代化的港口也靠不了岸——现代很多船只入港靠码头的时候，也是用顶推船把它‘推’靠上去，我这样的操船水平，船进港之后不坐滩不搁浅就是RP大爆发了。”
+"That's right. A shallow-draft coastal general cargo ship could be even shallower. The problem is, I don't have the local hydrographic data—no, I don't have the Ming Dynasty hydrographic data. And without a pilot, and with a makeshift engine crew, we wouldn't be able to dock even in a modern port. Many modern ships use tugboats to 'push' them to the pier when entering a port. With my level of ship-handling, it would be a miracle if the ship doesn't run aground or get stranded after entering the port."
 
-　　“轮船少说得好几千万吧。花几千万搞个大和旅馆？”
+"A ship costs tens of millions, right? Spend tens of millions to get a 'Hotel Yamato'?"
 
-　　“其实我的建议是用驳船。平甲板或者敞口驳船都可以。”蒙德大胆的提出了一个完全不华丽，被众人一致鄙视的建议。不过他视而不见。至少在他的专业领域，还没发现谁是内行的，这大大的壮了他的胆气——说错啥也不会被人狠拍了。
+"Actually, my suggestion is to use barges. Flat-deck or open-hatch barges would both work." Meng De boldly proposed a completely unglamorous suggestion that was unanimously despised by the crowd. But he ignored them. At least in his field of expertise, he hadn't found anyone who was an expert, which greatly boosted his courage—even if he said something wrong, no one would be able to call him out on it.
 
-　　“是用拖轮拖的？那不是在河里的跑的吗？”
+"The kind towed by a tugboat? Don't those run on rivers?"
 
-　　“我说的是海运驳船，一般是用在沿海地区，载重吨在1500－8500吨之间都有，有一些驳船是有动力可沿海短程航行的。这种船吃水非常浅，1500吨的吃水不过2米。”
+"I'm talking about sea-going barges. They are generally used in coastal areas, with deadweight tonnage ranging from 1,500 to 8,500 tons. Some barges are self-propelled and can sail short distances along the coast. These ships have a very shallow draft. A 1,500-ton one has a draft of just 2 meters."
 
-　　一艘典型的自航甲板驳船性能如下：
+A typical self-propelled deck barge has the following specifications:
 
-　　实际载重：1500吨
+*   Actual Deadweight: 1,500 tons
+*   Gross Tonnage: 1,411 tons
+*   Net Tonnage: 342 tons
+*   Length Overall: 61 meters
+*   Molded Breadth: 13.6 meters
+*   Molded Depth: 3.2 meters
+*   Draft: 1.832 meters
+*   Navigation Area: Coastal
+*   Main Engine Power: 330KW
 
-　　总吨：1411吨
+It could transport all kinds of general cargo and containers without any problem. The disadvantages were that it was very slow, had a short range, and poor seakeeping ability, making it suitable only for short-distance coastal freight. Of course, these were not problems for the transmigrators.
 
-　　净吨：342吨
+However, after comprehensive consideration, the decision was still to make general cargo ships the primary choice, with self-propelled barges as a backup only if the budget was insufficient. The reason was simple: self-propelled barges have no lifting and unloading equipment—they rely entirely on port facilities. For the transmigrators, manually unloading thousands of tons of materials was basically a myth, not to mention some items weighing tens or hundreds of tons, which couldn't be moved by any number of people. General cargo ships, on the other hand, were usually equipped with derricks and various loading/unloading equipment.
 
-　　总长：61米
+"I have an idea." Wu De from the sports group, who had served in the maritime police district and was part of the transmigrators' future naval core, also participated in this ship selection meeting.
 
-　　型宽：13.6米
+"Even if the cargo ship doesn't run aground, using it as a warship is completely impractical." Wu De flicked the dust off his sleeve. "Large cargo ships have a deep draft, are complex to handle, and their turning speed isn't much faster than a sailing ship. No matter how powerful the ship is, will the enemy come to fight you head-on after getting a taste of it once? They have a numerical advantage and can wage a war of maritime harassment along the shipping routes and coasts. If a fight breaks out, we'll be stretched thin. Even if we go out to sea and sink a few of their ships, the rest will scatter and flee into shallow waters. What can you do to them then? Lower a lifeboat to chase them? What we need is sea control. Such a lone, fuel-guzzling, and labor-intensive ship is too wasteful."
 
-　　型深：3.2米
+The magnificent, multi-turreted ironclad battle-freighter was being criticized. Everyone felt a pang of regret, but they also thought that what this former naval officer said was correct.
 
-　　吃水：1.832米
+"I was a fisherman myself and used to operate a fishing boat in the production team. During my military service, I saw the navy also using fishing boats. A 200-400 ton boat has a long range and is seaworthy. Wouldn't it be better as the main force of the transmigrator navy than some ironclad multi-turreted battle-freighter? If nothing else, it's much faster and uses less fuel."
 
-　　适航区域：沿海航区
+"And it can fish!"
 
-　　主机功率：330KW
+"Right, it can also fish. These types of boats are usually trawlers, very durable."
 
-　　运送各类干杂货和集装箱都没问题，缺点是速度很慢，续航力短，耐波性较差，只能在用于短途沿海货运。当然这对穿越众来说都不成问题。
+"Fishing boats are not easy to buy," Meng De objected. "The paperwork from the fisheries administration is too complicated."
 
-　　但是综合考虑下来，决定还是以杂货轮为主要选择对象，只有在预算不够的情况下才购买自航驳船作为候补。原因很简单，自航驳船没有起重装卸设备——完全依赖港口的装卸设备。对穿越众来说，去徒手卸载成千吨的物资基本就是神话，更不用说某些几十吨上百吨的东西，再多的人也扛不下去。而杂货轮一般都设有吊杆和各种装卸设备。
+"It doesn't matter. We just won't declare it for fishing purposes after we buy it. Anyway, once we transmigrate, we can use it for whatever we want."
 
-　　“我有一个想法。”体育组的邬德因为曾经在水警区服役，属于穿越众未来的海军班底，所以也参加了这次船只选型会议。
+There were differing opinions on this issue within the Executive Committee; some thought it would unnecessarily complicate the operation. However, the majority of the committee expressed their support—Hainan, where the transmigrators planned to develop their base, was surrounded by rich fishery resources. The Beibu Gulf is still an important fishing ground to this day, with annual fishing disputes between Chinese and Vietnamese fishermen. It was likely to be even richer in the 17th century. One or several fishing boats could enrich the transmigrators' protein source. Modern fishing boats are light, agile, and easy to operate. They could perfectly serve as the transmigrators' early coastal maritime force. After all, the narrowest part of the Qiongzhou Strait is less than 18 kilometers wide; even a very small boat could easily cross it. Without ships for early warning at sea, they would likely only discover the enemy when they were within sight of the shore, which would be very passive.
 
-　　“就算货船不搁浅。拿货船做军舰也根本不实用。”邬德掸了下袖子上灰尘，“大型货船吃水深，操船复杂，转向掉头也不见得能比帆船快多少。船再厉害，对手吃到一次苦头还会来跟你正面硬拼吗？他们有数量优势，完全可以在航线上和沿海进行海上袭扰战，打起来我们就顾此失彼了。就算出海打掉它几艘，余下分散逃开往浅水的地方一躲，你能拿他怎么样？吊救生艇下去追么？我们要的是制海权，这么一艘孤零零又费油又费人力的船，太浪费。”
-
-　　华丽的铁甲多炮塔战列货船被人批斗了，所有人都感到痛心，但是一想这位前海军军官说得也没错。
-
-　　“我自己是渔民，当年自己在生产队就开过渔船。在部队服役的时候又看到海军也用渔船，200－400吨的船，续航力大又耐风浪，用来当穿越海军的主力不是比啥铁甲多炮塔战列货船强么？别的不说光速度就快得多，用油也少。”
-
-　　“还能捕鱼！”
-
-　　“对，还能捕鱼，这类船一般都是拖网船，经用的很。”
-
-　　“渔船不大好买。”蒙德反对道，“渔政上的手续太复杂了。”
-
-　　“没关系，我们买之后不做渔业用途申报就是了，反正穿过去了拿它干啥都行。”
-
-　　这个问题在执委会中有不同的看法；认为徒然增加行动的复杂性。但是执委会的多数还是表达了支持意见——穿越众要作为基地发展的海南，周边海域渔业资源十分丰富——北部湾至今还是重要的渔场，每年中越渔民都会在那里发生渔业纠纷。想来17世纪只会更加丰富，有一艘或者几艘渔船可以丰富穿越者的蛋白质来源。现代渔船轻捷灵活，操作简便。完全可以充当穿越众的早期近岸海上力量——要知道琼州海峡最窄处不到18公里，很小的船都能轻易过去。没有船只在海上进行早期预警，恐怕要等敌人进入岸边视野才会被发现，十分被动。
-
-　　于是方案就这样确定下来。邬德被委托进行渔船的选型，同时提出相关的备件、物资采购清单。会议结束之后，在蒙德的建议下，选拔了一批身体条件好，对航海有一定兴趣的穿越众去参加培训——蒙德利用工作便利，找了一个自己家里就经营几条沿海货船的朋友，把人送上船去一对一的直接培训有关技能。
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
+And so, the plan was finalized. Wu De was entrusted with selecting the fishing boat models and proposing a corresponding list of spare parts and materials for procurement. After the meeting, at Meng De's suggestion, a group of transmigrators with good physical condition and some interest in navigation were selected to participate in training. Meng De used his work connections to find a friend whose family operated several coastal cargo ships and sent the people onto the ships for direct, one-on-one training in relevant skills.
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma千瞩"
