--- a/_posts/2009-10-13-1-04300.md
+++ b/_posts/2009-10-13-1-04300.md
@@ -1,108 +1,110 @@
 ---
 layout: post
-title: 第四十三节 资源标准化
+title: "Section 43: Resource Standardization"
 category: 1
 path: 2009-10-13-1-04300.md
 tag: [normal]
 ---
 
-　　“老文，船搞到了！”走进办公室的[王洛宾][y003]神采飞扬，手里拿着个文件夹，“全部搞下来了，许可证、执照……真是有钱能使鬼推磨，三个月全部都给搞定了。”
+"Old Wen, I got the ship!" [Wang Luobin][y003] burst into the office, his face beaming, holding a folder. "Got everything sorted out, the permits, the licenses... Money really does make the world go round. It only took three months to get it all done."
 
-　　“到底是船还是执照？”[文德嗣][y002]和[萧子山][y001]都胡涂了。
+"The ship or the licenses?" Both [Wen Desi][y002] and [Xiao Zishan][y001] were confused.
 
-　　“都有。这是船的资料，我和蒙德跑了好多地方。就是这条船，包你满意！”
+"Both. Here's the ship's information. Meng De and I ran all over the place. This is the one. I guarantee you'll be satisfied!"
 
-　　这艘如同“五月花”般建立起一个崭新世界的船只，最终被称呼为“圣船”，永久的保留在当年登陆的地方。但是此刻，它只是一艘船龄超过40年，接近报废的杂货轮。
+This ship, destined to build a new world like the *Mayflower*, would eventually be called the "Holy Ship" and be permanently preserved at the landing site. But for now, it was just a general cargo ship, over 40 years old and nearing the end of its service life.
 
-　　该船是20世纪70年代中后期国内船厂仿制波兰造的“丰城”型建造的同级远洋货船，登记总吨6557.89吨。净吨3608.3吨。载重吨7167吨。可载货6000吨。船舶总长135.26米，宽17.74米。型深10.4米，满载吃水7.65米。有5个货舱。自带4台吊杆（2台重吊）。航速11节。
+The ship was an ocean-going vessel of the same class as the Polish-designed "Fengcheng" type, built in a domestic shipyard in the mid-to-late 1970s. Its registered gross tonnage was 6,557.89 tons, with a net tonnage of 3,608.3 tons and a deadweight of 7,167 tons. It could carry 6,000 tons of cargo. The ship's total length was 135.26 meters, with a beam of 17.74 meters. Its molded depth was 10.4 meters, and its full-load draft was 7.65 meters. It had five cargo holds and was equipped with four derricks (including two heavy-lift ones). Its cruising speed was 11 knots.
 
-　　该船可储运多种类型的货物。其第一、二、三、五舱装干杂货，第四舱为冷冻货舱，分隔为3层，装载冷冻货物，第一、五舱最底层为植物油舱，装载散装植物油。70年代末它还加固了甲板，扩大舱口，试验性的搭载过集装箱，简直就是多才多艺。
+The ship could store and transport various types of cargo. Its first, second, third, and fifth holds were for dry general cargo. The fourth hold was a refrigerated cargo hold, divided into three levels. The lowest levels of the first and fifth holds were designed as vegetable oil tanks for bulk transport. In the late 70s, its deck had been reinforced and its hatches enlarged to experimentally carry containers. It was truly a versatile vessel.
 
-　　因为原来是作为远洋轮设计的，载货量大，吃水深，所以在近海运输中成本过高，长期处于闲置状态。
+Because it was originally designed as an ocean-going ship with a large cargo capacity and deep draft, its operating costs for coastal transport were too high, and it had been idle for a long time.
 
-　　“这船是长期闲置，模样有点惨，”[王洛宾][y003]介绍着，“不过因为是封存的，整体状态还行。我和小蒙一起检查了一遍，船上主要设备老了点，但都能用。”
+"The ship has been laid up for a long time, so it looks a bit rough," [Wang Luobin][y003] explained. "But because it was in preservation, its overall condition is okay. Little Meng and I inspected it together. The main equipment on board is a bit old, but it's all functional."
 
-　　“多少钱？”[文德嗣][y002]紧张起来，这是一艘不折不扣的远洋轮，要买下来不得好几千万！
+"How much?" [Wen Desi][y002] became nervous. This was a genuine ocean-going liner; buying it would surely cost tens of millions!
 
-　　“1200万。”
+"12 million."
 
-　　还好，这个价钱小于他的心理价位。执委会对船的预算是3000万。
+That was a relief. The price was below his psychological threshold. The Executive Committee's budget for the ship was 30 million.
 
-　　“不过，最好要花点前把设备都维修保养一下，设备老化的不少，干脆都搞好一些吧。”
+"However, it would be best to spend some money to repair and maintain the equipment. A lot of it is aging. We might as well get it all in good shape."
 
-　　“行，过去以后也没地方修理，各种设备都要保证能用上几年。”
+"Fine. We won't have a place to repair it after we go over. We need to ensure all the equipment can last for a few years."
 
-　　“估计要花二三百万……”
+"It will probably cost two or three million..."
 
-　　“行，你花吧。”[文总][y002]咬了下牙，提醒自己钱不花白不花。
+"Fine, spend it." [Director Wen][y002] gritted his teeth, reminding himself that the money was meant to be spent.
 
-　　“因为预算有富余，蒙德又提议再加买二艘船。”
+"Because we have a budget surplus, Meng De suggested buying two more ships."
 
-　　“什么？！”
+"What?!"
 
-　　“一艘是他提议的自航式甲板驳船，1500吨的，350万。”
+"One is the self-propelled deck barge he proposed, 1,500 tons, for 3.5 million."
 
-　　“要修么……”
+"Does it need repairs..."
 
-　　“基本不用，稍微保养一下好了。有个一二十万就行。”
+"Basically no, just a little maintenance. One or two hundred thousand should be enough."
 
-　　“成。”[文总][y002]心想自从[王工][y003]搞起了采购，口气是越来越大了。
+"Done." [Director Wen][y002] thought to himself that ever since [Engineer Wang][y003] took over procurement, he had started talking bigger and bigger.
 
-　　“还有一非常有用的好船，你绝对会高兴。”
+"And there's another very useful, good ship. You will definitely be happy."
 
-　　“我高兴极了，别卖关子了……”[文总][y002]已经开始有气无力了。
+"I'm overjoyed. Stop keeping me in suspense..." [Director Wen][y002] was starting to feel faint.
 
-　　“一艘登陆挺！刚从部队退役下来，保养的非常好。连机枪座都完好无损。”
+"A landing craft! Just decommissioned from the military, very well-maintained. Even the machine gun mounts are intact."
 
-　　“登陆艇？”[萧子山][y001]的眼睛也睁大了。
+"A landing craft?" [Xiao Zishan][y001]'s eyes widened as well.
 
-　　“对，1975年秦皇岛造船厂建造的多用途登陆艇。”
+"Yes, a multi-purpose landing craft built in the Qinhuangdao Shipyard in 1975."
 
-　　总吨89吨，净吨50吨，船长28米，宽5.4米，高2.7米。船首电动门，兼做上车跳板。开敞式，可装标准卡车2辆，或重卡1辆。吃水1.2米。
+Gross tonnage 89 tons, net tonnage 50 tons, length 28 meters, beam 5.4 meters, height 2.7 meters. It had an electric bow door that doubled as a ramp. Open-top design, capable of carrying two standard trucks or one heavy truck. Draft 1.2 meters.
 
-　　“呵呵，而且这船够便宜，才16万！邬德都说了，这么便宜跟白给一样。”
+"Hehe, and this boat is cheap, only 160,000! Wu De said it's so cheap it's practically a giveaway."
 
-　　“邬德说的渔船呢？”
+"What about the fishing boats Wu De mentioned?"
 
-　　“他看中了好像叫什么8154型单拖网渔船的，200吨的。船况很好，也是部队退役的。120万一艘。申请买4艘。此外，还需要购买很多船用的备件、设备和专用消耗品。”
+"He has his eye on something called a Type 8154 single-trawler fishing boat, 200 tons. The condition is very good, also decommissioned from the military. 1.2 million per boat. He's applying to buy four. In addition, we need to purchase a lot of spare parts, equipment, and special consumables for the ships."
 
-　　“都买吧。钱只要不超过预算就行。我们快没钱了。”
+"Buy them all. As long as the money doesn't exceed the budget. We're running out of money soon."
 
-　　也许是过去在公司上班时候遇到过的财务大姐留下得阴影，穿越公司的财务股负责人程栋虽然是个金融业出身的年轻男士，[文总][y002]也很少光临。最近更是连电话都不怎么敢打了——程栋同学每次见到他都痛心疾首的告诉他目前公司的财务状况是如何的危险，利润是根本没有，开销是如何的巨大，太多不符合财务手续的支出，账目上的漏洞如何的有隐患，那些空头公司面临的问题又是如何，如果[文总][y002]真得是在经营一家集团公司，恐怕此刻想潜逃的心都有了。
+Perhaps it was the lingering trauma from the finance ladies he had encountered in his past corporate life, but [Director Wen][y002] rarely visited Cheng Dong, the young man from the financial industry who was in charge of the Transmigration Company's finance department. Recently, he hardly even dared to call him. Every time Cheng Dong saw him, he would lament in anguish how dangerous the company's current financial situation was, how there were no profits at all, how huge the expenses were, how many expenditures did not comply with financial procedures, how many loopholes there were in the accounts, and the problems faced by those shell companies. If [Director Wen][y002] were really running a corporate group, he would probably be thinking of absconding by now.
 
-　　现在他们下属的各个相关公司账户，秘密金库的现钞都还有很多结余，但是这些钱都将是要支付的货款或者核好的项目预算。真正保持机动的预留费用减少到不足二百万。最近三个月，穿越公司已经在偷偷出手那些可能会给自己带来麻烦的最后一批大明出品的物资：名贵中药材、麝香、各种硬木和高级香料。
+Currently, their various subsidiary company accounts and the cash in their secret vaults still had a lot of surplus, but all this money was earmarked for paying for goods or approved project budgets. The truly mobile reserve funds had been reduced to less than two million. For the past three months, the Transmigration Company had been secretly selling off the last batch of Ming Dynasty goods that could bring them trouble: precious Chinese medicinal herbs, musk, various hardwoods, and high-grade spices.
 
-　　这些东西因为市场很小，一旦有大批的货物进入就会引起市场波动——[文总][y002]很希望在大明的蝴蝶效应成为飓风，但在本时空，市场上蝴蝶效应却可能会让他们彻底曝光——最近广东的硬木市场一路下跌，已经引起了某些财经记者的兴趣。
+These items had a very small market, and a large influx of goods would cause market fluctuations. [Director Wen][y002] was very keen for the butterfly effect to become a hurricane in the Ming Dynasty, but in their own time, a butterfly effect in the market could lead to their complete exposure. Recently, the hardwood market in Guangdong had been falling, which had already attracted the interest of some financial reporters.
 
-　　快点到农历八月十五吧！[文德嗣][y002]望着窗户外渐渐变圆的月亮，心里不合实际的企望着。
+*Hurry up and get to the 15th of the eighth lunar month!* [Wen Desi][y002] thought unrealistically, looking at the moon, which was gradually becoming full outside the window.
 
-　　就在此地的某栋办公楼内的阶梯型大会议室内，此时正洋溢着一种欢乐而严肃的气氛，窗户上低垂的大幅绿色遮光窗帘又给人奇怪的神秘感。油漆剥落，横档折损的一排排长椅上坐满了人，或窃窃私语，或双目呆滞，或故作镇定，左顾右盼。他们的共同点就有面前都开着一台笔记本电脑。黝暗的光线下，三四十台笔记本同时运转发出连绵不绝的风扇嗡嗡声。
+***
 
-　　主席台上随意的坐着三四个人，面前也堆着好几台笔记本和一个巨大的机箱，无线路由器的灯光闪烁着。他们的身后挂着巨大的投影幕。投射其上的是一张穿着暴露身材火爆的女郎照片。下面打着三个大字：苍井空，接着又是一排号码P01701105－3。
+In a tiered lecture hall in one of the office buildings here, a joyous yet solemn atmosphere prevailed. The large, green blackout curtains hanging low over the windows added a strange sense of mystery. The rows of long benches, with their peeling paint and broken slats, were filled with people, some whispering, some staring blankly, some pretending to be calm while looking around. The common thing they all shared was a laptop open in front of them. In the dim light, the continuous hum of fans from thirty or forty laptops running simultaneously filled the air.
 
-　　“大家注意，这次的标准号码是P01701105－3，姓名：苍井空。开始同步化资源。”
+Three or four people sat casually on the stage, with several laptops and a huge computer case piled in front of them. The lights of a wireless router blinked. Behind them hung a huge projection screen. Projected onto it was a photo of a scantily clad, voluptuous woman. Below it were three large characters: Sola Aoi, followed by a string of numbers: P01701105-3.
 
-　　随着笔记本上的网卡灯不断闪烁，桌子上的服务器开始通过无线局域网指令已经安装了远程控制软件的每一台笔记本进行智能化搜索。第一步是搜索全部带有苍井空、苍井そら、あおいそら、AoiSola关键词的所有视频各式文件；第二部搜索由某人提供的苍井空全部AV目录进行汉语、假名和日语罗马拼音搜索，第三步，进行文件大小和视频各式比对。
+"Attention everyone. This time, the standard number is P01701105-3, name: Sola Aoi. Begin resource synchronization."
 
-　　最后，软件在服务器上生成了报告，该报告提示了哪些笔记本上有重复的同类资源，哪些笔记本上的同类资源在视频格式上更有优势。
+As the network card lights on the laptops flickered, the server on the table began to issue commands through the wireless local area network to each laptop, which had remote control software installed, to conduct an intelligent search. The first step was to search for all video files with the keywords Sola Aoi, 蒼井そら, あおいそら, and AoiSola. The second step was to search for Sola Aoi's entire AV catalog, provided by someone, in Chinese, kana, and Japanese romaji. The third step was to compare file sizes and video formats.
 
-　　几乎同时，每一台笔记本的屏幕上都跳出了提示：P01701105－3号资源开始优化同步！程序自动地删除了笔记本上那些程序认为重复或者质量欠佳的视频文件，那些目前没有，或者质量较现在好的视频文件则开始自动上传。
+Finally, the software generated a report on the server, which indicated which laptops had duplicate resources and which laptops had resources with better video formats.
 
-　　“啊，我的苍井空全集怎么都开始删除了？！”有人惨叫着开始疯狂的按键盘，“我挂了一个月的BT才下全的啊啊啊啊……”
+Almost simultaneously, a prompt popped up on the screen of each laptop: Resource P01701105-3 optimization and synchronization beginning! The program automatically deleted video files on the laptops that it deemed duplicates or of poor quality. Video files that were currently missing, or of better quality than the existing ones, began to upload automatically.
 
-　　“大家不要动键盘，程序是自动执行的！”主席台上的一个人对着麦克风在吼叫，“你吼个P啊，我们资源服务器上的苍井空都是DVD版MKV高画质压缩，你那几百M一本的RMVB也出来现！——下回去让你精尽人亡！”他说着汗珠已经滴落到桌上——在这初秋的时节，同几十个男人和他们的电脑一起窝在这里，不热才怪。
+"Ah, why is my entire Sola Aoi collection being deleted?!" someone screamed, frantically mashing their keyboard. "It took me a whole month of BT downloading to get the full set, ahhhhh..."
 
-　　随着一阵叹息和笑声之后，屏幕上又出现了下一位AV女优：
+"Everyone, don't touch your keyboards! The program is running automatically!" a person on the stage shouted into a microphone. "What the hell are you yelling about? The Sola Aoi on our resource server is all DVD-rip MKV high-quality compression. You and your few-hundred-megabyte RMVB files have no place here! When you download it back, you can fap yourself to death!" As he spoke, beads of sweat dripped onto the table. In this early autumn season, cooped up with dozens of men and their computers, it would be strange if it wasn't hot.
 
-　　标准号码P01701105－4，姓名：朝美穗香，Mihiro，みひろ
+After a wave of sighs and laughter, the next AV actress appeared on the screen:
 
-　　……
+Standard number P01701105-4, name: Mihiro, みひろ
 
-　　所谓的资源标准化，是为了执委会整合所有非物质资源的一个统一行动。来报道的每个穿越众无差别的都携带了笔记本电脑、无数TB级别的硬盘、数不清的光盘。包含了各种电子资源。除了日本AV这类群众喜闻乐见的东西，还有整套的各种论文、期刊数据库、几个国内主流的电子图书馆数据库；各种电影、电视剧、文艺节目；广播电视大学远程教育节目、大学讲座录像；电子版的各类图纸、CAD设计图、工业手册；各类软件……目前网络上能找到的和不能找到的，被电子化的图文媒体资源几乎都被带到了这里。这些海量的信息被分散在许多载体上，即有大量的重复浪费了空间又不够安全。因此由信息组负责，对每一批次报道人员带来的此类资源统一检查、归类、优化和备份，分门别类的进行归类编目，做出索引来以便查询。
+...
 
-　　每一台笔记本、每一块硬盘到每张光盘资源组都要制作条码化然后输入数据库。原则上，信息组并不征用个人带来的笔记本，但是全部光盘和硬盘则收归信息组集中管理，信息组有权对硬盘上的资源进行删除和储存，以便最优化管理。
+So-called resource standardization was a unified action by the Executive Committee to integrate all non-material resources. Every transmigrator who reported for duty brought with them, without exception, laptops, countless terabytes of hard drives, and innumerable discs, containing all sorts of electronic resources. Besides popular items like Japanese AV, there were complete sets of various academic papers, journal databases, several mainstream domestic electronic library databases; various movies, TV series, and entertainment programs; radio and television university distance learning programs, university lecture videos; electronic versions of various blueprints, CAD design drawings, and industrial manuals; all kinds of software... Almost all digitized text and media resources, both those that could be found online and those that couldn't, were brought here. This massive amount of information was scattered across many carriers, with a lot of duplication wasting space and being insecure. Therefore, the Information Group was responsible for uniformly checking, classifying, optimizing, and backing up these resources brought by each batch of reporting personnel, cataloging them by category, and creating an index for easy searching.
 
-　　至于笔记本的储存空间依然是由个人支配，在软件进行完资源标准化处理之后，每个人都可以从信息组资源服务器里下载个人感兴趣的东西——当然，最核心的资源，依然需要授权。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
+Every laptop, every hard drive, and every disc had a barcode made for it by the resource group and was then entered into the database. In principle, the Information Group did not confiscate personal laptops, but all discs and hard drives were collected for centralized management. The Information Group had the right to delete and store resources on the hard drives for optimal management.
+
+As for the storage space on the laptops, it remained under personal control. After the software completed the resource standardization process, everyone could download things of personal interest from the Information Group's resource server—of course, the most core resources still required authorization.
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
