--- a/_posts/2009-10-16-1-04600.md
+++ b/_posts/2009-10-16-1-04600.md
@@ -1,166 +1,154 @@
 ---
 layout: post
-title: 第四十六节 最后的插曲
+title: "Section 46: The Final Interlude"
 category: 1
 path: 2009-10-16-1-04600.md
 tag: [normal]
 ---
 
-　　就在这个杂草丛生的训练场上，聚集了全体的穿越众们，召集了第一届全体大会。
+On this weed-strewn training ground, all the transmigrators gathered for the first General Assembly.
 
-　　尽管许多事在几个月前就被已经制定出方案，但在一些关键的问题上还是有悬而未决，争议很大没有得出结论。委员会决定在穿越开始之前，把这些问题全部以投票的方式写成成文法，作为日后行动的指导纲领。这就是后来史称的“训练场大会”。
+Although many plans had been formulated months ago, some key issues remained unresolved, with significant controversy and no conclusion. The committee decided that before the transmigration began, all these issues would be written into formal law by vote, to serve as the guiding principles for future actions. This later became known in history as the "Training Ground Assembly."
 
-　　几个月来在穿越者论坛上激烈讨论的方案一一拿出来供大家讨论，经过讨论和修正，几个重要方案获得了大家的认同，虽略有反对的声音，但是没有太多人支持。
+The proposals that had been fiercely debated on the transmigrator forums for months were brought out one by one for everyone to discuss. After discussion and revision, several important proposals gained everyone's approval, with only a few dissenting voices that lacked significant support.
 
-　　首先大会先就各种名词做了一系列的定义：
+First, the assembly made a series of definitions for various terms:
 
-　　穿越众/穿越者：所有参加这次时空移民的本时空居民。不分性别、年龄、职业、民族。
+*   **Transmigrator (穿越众/穿越者):** All residents of this time-space participating in this temporal migration, regardless of gender, age, profession, or ethnicity.
+*   **Native (本地人):** All local people of the 17th-century time-space, regardless of gender, age, profession, ethnicity, or nationality.
 
-　　本地人：所有17世纪时空的当地人。无论性别、年龄、职业、民族、国籍。
+Because they had no practical experience in how a government should operate, the entire system was guided by the principle of simplicity and clarity, without getting entangled in excessive professional jargon. The meeting decided:
 
-　　因为对政权机构该如何运作没有实践经验，所以整个系统以简单明了为指导思想，不纠缠过多的专业术语。会议决定：
+The supreme authority of the future transmigrator polity would be the **Transmigrator General Assembly (穿越大会)**.
 
-　　未来的穿越政体的最高权力机构为穿越者全体大会（穿越大会）。
+The General Assembly has the power to elect and reorganize the Transmigrator Executive Committee, formulate various laws and policies, and decide on important internal and external affairs. Under normal circumstances, it convenes once a month. In case of major emergencies, it can be convened by a motion of three or more Executive Committee members or more than one-third of the transmigrators. Except in special circumstances, the attendance of transmigrators at the assembly must exceed 90%.
 
-　　穿越大会有选举、改组穿越执行委员会、制定各项法律政策、决定重要内外事务的权力。在正常情况下每月召开一次，当遇有重大紧急事项时可由三名以上执委会委员或三分之一以上穿越者临时动议召开。除特殊情况外，出席大会的穿越者必需多于90％。
+All transmigrators aged 18 and above automatically become members of the General Assembly, with the right to elect and be elected as members of the Executive Committee. The number of members of the General Assembly cannot be increased or decreased. Upon retirement, a transmigrator's seat can be inherited by one designated child in a 1:1 ratio.
 
-　　全体穿越者凡年满18周岁自动均成为穿越大会成员。有选举和被选举成为执委会委员的权利。穿越大会的成员数量不可增减，穿越者的席位在其退休时可按1：1的比例由其指定子女一人继承。
+The **Transmigrator Administrative Executive Committee (执委会)** is the permanent administrative body of the transmigrators, with the authority to stipulate administrative measures, formulate administrative regulations, and issue decisions and orders; to propose motions to the General Assembly; and to be responsible for all administrative affairs.
 
-　　穿越行政执行委员会（执委会），是穿越者的常设行政机构，有权规定行政措施，制定行政法规，发布决定和命令；向穿越大会提出议案；负责所有行政性事务工作。
+Its members consist of full-time executive commissioners and the heads and deputy heads of the various administrative professional departments under the Executive Committee.
 
-　　其成员由专职执行委员和执委会下属的各个行政专业部门的正副负责人组成。
+1.  **Committee for Industry, Communications, Energy, and Transport (Ministry of Industry)**
+2.  **Committee for Agriculture (Ministry of Agriculture)**
+3.  **Committee for Foreign Affairs and Commerce (Ministry of Commerce)**
+4.  **Committee for Military Affairs (Ministry of Military)**
+5.  **Committee for Internal and Civil Affairs (Ministry of Internal Affairs)**
+6.  **Planning Commission (计委)**
 
-　　1、工业、通讯、能源、交通委员会（工业部）
+Under each committee, various professional groups were established. Considering the limited number of professionals, the actual deployment of personnel and materials was still uniformly scheduled at the committee level.
 
-　　2、农业委员会（农业部）
+The newly established Planning Commission was tasked with managing the collection, storage, auditing, and distribution of various resources; assessing the use of resources; and overseeing the implementation of various construction policies.
 
-　　3、外交与商业委员会（商务部）
+In addition to the various ministries, the Executive Committee directly administered:
 
-　　4、军事委员会（军事部）
+*   **General Affairs Group:** Responsible for paperwork, file collection and organization, and coordinating the work of the committees.
+*   **IT Group:** Responsible for the operation of all computer systems.
+*   **Information and Intelligence Group:** Manages all the information materials brought by the transmigrators.
+*   **Policy Advisory Group:** Provides policy advice to the General Assembly and the Executive Committee.
 
-　　5、内务民政委员会（内务部）
+The leaders of these directly administered groups were also members of the Executive Committee.
 
-　　6、计划委员会（计委）
+There were many different opinions on the departmental setup. The focus was mainly on whether the power of the Planning Commission was too great and who would supervise the potential problems that might arise in the operation of the Executive Committee. Therefore, among the three full-time executive commissioners, in addition to the Chairman of the Executive Committee and the Secretary-General of the Executive Committee, a **Supervisory Commissioner** was also established.
 
-　　每个委员会下，又分设各专业组，考虑到专业人手有限，实际在人员和资材运用上还是以委员会为单位进行统一调度。
+Thus, the entire Executive Committee had a total of 19 members. Major decisions of the Executive Committee must be approved by a majority of the General Assembly to be effective. The term of office is 4 years. If a minister or other member gives up their seat before the end of their term, their department will hold a joint meeting to elect a successor to fill the seat until the end of the term or the next election. If the department cannot convene a meeting to decide, the Executive Committee may nominate or appoint a person to exercise the powers until the General Assembly convenes to elect a new person. The committee meets twice a week and can be convened at any time in an emergency.
 
-　　其中新设的计划委员会的任务是管理各类资源的收存、保管、审计、发放；考核资源的使用情况；负责搜集各项建设政策的实施。
+Immediately after, the transmigrators voted to pass the Executive Committee's first proposal: to authorize a **temporary state of emergency** in the early period of the transmigration. During this period, except for matters involving declarations of war, treaty-making, and major personnel reorganizations, all affairs would be handled by the Executive Committee with full authority. The Executive Committee has the right to implement any policy and action it deems beneficial to all transmigrators. The state of emergency will last for 6 months from D-Day, after which the General Assembly will decide whether to extend it.
 
-　　在各部之外，执委会直辖：
+Until the General Assembly deems it necessary to amend the transmigrator welfare policy, all transmigrators will enjoy a **supply system for basic necessities**, including food, clothing, and healthcare, all free of charge.
 
-　　总务组：负责文案工作和档案收集整理，协调委员会工作。
+The distribution of benefits would use a **joint-stock system** for dividends.
 
-　　IT组：负责全部计算机系统运行。
+The equipment brought for the transmigration is divided into two parts: personal and public.
 
-　　情报资讯组：管理掌握穿越者携带来的全部资讯材料
+*   **Personal Part:** (e.g., someone's private liquor) The ownership and right of use belong entirely to the individual.
+*   **Public Part:** Composed of items and cash contributed by the transmigrators to the organization (or items originally privately owned but requisitioned by the committee). Once contributed, the items belong entirely to the organization, and their distribution and use are decided entirely by the organization. Accountants and asset liquidators will conduct a comprehensive liquidation based on the pre-transmigration value and post-transmigration use value, which is then converted into **dividend-only shares** and distributed to each member.
 
-　　政策资询小组：为穿越大会和执委会提供各项政策资询。
+Every transmigrator, regardless of whether they contributed funds or equipment, unconditionally receives **100,000 original dividend shares**—children are no exception. This is to provide a minimum guarantee for transmigrators with limited financial means.
 
-　　直辖小组的组长同样是执委会委员。
+The unit of stock is the **point coupon** (the internal accounting currency of the transmigrators), with 1 share = 1 point coupon.
 
-　　在部门设置上，有比较多的不同意见。焦点主要是在计委的权力是否过大和谁来监督执委会运行中的可能产生的问题上。因此三名专职执行委员中，除了执委会主席、执委会秘书长之外，另设一名监察委员。
+The distribution of benefits is divided into 5 parts:
 
-　　这样，整个执委会共有执委19人。执委会在决定重大事务时必须经全体大会多数批准才有效。任期4年。如果某位部长等在服务期满之前放弃其席位，其所在部门将举行共同会议，推选一人接替其席位，直到任期结束或下一次选举。如部门不能开会决定，执行委员会可以根据提名或指定一名人员来行使职权，直到全体大会召开会议选出新人员。该会议每周召开二次，紧急情况下可随时动议召开。
+1.  **Positional Salary:** Each transmigrator receives a different salary according to their job, i.e., distribution according to labor. In principle, the highest salary will not exceed twice the lowest.
+2.  **Bonuses:** To stimulate work enthusiasm, bonuses (in kind or in accounting currency) are given to those who make significant contributions to the work of the transmigrators. Bonuses are one-time and temporary, divided into three levels: Assembly level, Department level, and Group level.
+3.  **Allowances:** Extra allowances for transmigrators with special skills, engaged in dangerous affairs, or working long hours.
+4.  **Dividends:** 10% of the total annual profits from the transmigrator organization's commercial institutions and the spoils of war from its military institutions will be extracted and distributed as stock dividends to each shareholder.
+5.  **Welfare Foundation:** 2% of the total annual profits will be extracted as special income for the Transmigrator Foundation. The proceeds of this foundation will be used to cover future welfare expenses and children's education costs for the transmigrators.
 
-　　随即穿越者们投票通过执委会的第一号提案：授权在穿越的早期为临时紧急状态时期，在该时期内除涉及宣战、缔约、重大人员改组之外，一切事务由执委会全权负责处理。执委会有权执行任何其认为对全体穿越者有利的政策和行动。紧急状态自D日起6个月，到期后，由全体大会决定是否延期。
+Shares only have dividend rights and only affect the amount of dividends received. If a General Assembly is convened, it is still one person, one vote, not one share, one vote.
 
-　　直到穿越大会认为需要对穿越者福利政策做出修改前为止，穿越众享受生活必须品供给制：包括伙食、服装、医疗保健。均无需付款。
+Upon the death of a transmigrator, half of their shares will be given to a person or institution designated in their will (no limit on the number), and the other half will be returned to the state. This applies to all shareholders.
 
-　　利益分配才用股份制的分红的方式。
+Currently, all benefit distribution is calculated in point coupons. Under normal circumstances, individuals cannot increase their shareholdings.
 
-　　穿越携带装备分成个人和公共2个部分。
+As for those with amorous intentions who had already proposed whether the transmigrator state could provide multi-child subsidies, the Executive Committee's answer was to wait until they actually had children. The issue of welfare was too complex and could not be planned in too much detail at present.
 
-　　个人部分（例如某人的私酒）所有权和使用权完全归个人所有。
+Overall, everyone was quite satisfied with the entire political and distribution system. After the meeting, everyone received their stock certificate—custom-printed at great expense by the Executive Committee at a local printing factory. It had the crisp feel of banknote paper, with blue ink and incredibly complex patterns. The central motif was a ship sailing on the waves under a rising sun. It was also printed with the holder's name, code, and a serial barcode—for re-issuance in case of loss or damage. The Executive Committee even specially provided a plastic waterproof pouch with a lanyard for each certificate.
 
-　　公共部分是由穿越众上缴给组织的物品和现金（或委员会征用的原属私人所有的物品）组成，物品上缴后完全归组织所有，物品的分配和使用完全由组织决定。由会计和资产清算师根据穿越前的价值和穿越后的使用价值进行综合清算，然后转化为只有分红权的股票发放会各成员手中。
+"200,000 shares, damn. I wonder how much dividend I'll get in the future. It should be enough to support 4-5 wives, right?"
 
-　　每个穿越众无论有无资金装备投入，均无条件获取价值10万股原始分红股——儿童也不例外——这是为了给经济条件有限的穿越众一个最低保障。
+"No ambition. What's this little dividend?" [Wu Nanhai][y009] stuffed his stock certificate into the waterproof pouch. "I hope that after I die, dozens of my children will fight over my inheritance!" He looked up at the 21st-century sky with great ambition. Under the sky of the 17th century, [Wu Nanhai][y009]—this otaku graduate of an agricultural university—would satisfy his grand ambitions.
 
-　　股票单位为点券（穿越众内部记账货币），1股=1点券。
+***
 
-　　利益分配分成4个部分：
+The first Saturday after the Mid-Autumn Festival holiday, just as Guo Yi had woken up, his mobile phone rang.
 
-　　1、职务薪金：各个穿越众根据其工作领取不同的薪金，也就是按劳分配。原则上职务薪金最高的不超过最低的2倍。
+It was his section chief.
 
-　　2、奖励：对穿越众的工作做出重大贡献的人，给予奖励（实物或者记账货币），激发大家的工作积极性。奖励是一次性的，临时性的。按发放级别分为大会级、部门级、小组级三级。
+"Little Guo, that Transmigration Company you investigated last time—"
 
-　　3、津贴：对穿越众中有特殊技能、从事危险事务、长时间劳动者的额外津贴。
+"Yes! I have submitted the relevant report."
 
-　　4、红利：穿越组织的商业机构盈利和军事机构战利品的总收益中每年度提取10％做为股票红利分发给各个持股成员。
+"There's a problem with this company. Get to the office within 20 minutes." The section chief hung up. This sent a cold sweat down Guo Yi's back—the words "there's a problem" were not used lightly. If they said there was a problem, it meant there was a big problem.
 
-　　5、福利基金会：穿越组织的商业机构盈利和军事机构战利品的总收益中每年度提取2％做为穿越者基金会的专项收入。该基金会的收益将用来负担未来穿越者的福利开支及子女教育费用。
+He arrived at the office in 18 minutes. In addition to his section chief, there was a leader from the agency's foreign affairs department, accompanied by two foreigners, a man and a woman. The woman was blonde and blue-eyed. The man, although having the black hair and black eyes of a pure-blooded Chinese, Guo Yi could tell from his years of work experience that he was an ABC (American-Born Chinese). These two foreigners looked fit and capable; they were most likely personnel from a law enforcement agency.
 
-　　股票只有分红权，只影响获得红利的多寡。如果召开全体穿越众大会，依然是一人一票而不是一股一票。
+"This is Xue Ziliang, and this is his partner, Sarlina," the section chief introduced. "They are field agents from the USA's Bureau of Alcohol, Tobacco, and Firearms. Half a month ago, the bureau issued a bulletin that several Chinese nationals had transported a large number of firearms and ammunition to Hawaii, rented a 100-ton yacht there, and then left port. The sailing papers they filed were for Vietnam. They suspect that these firearms and ammunition are on that boat."
 
-　　穿越众死亡，股票的一半根据他的遗愿给予他指定的人或者机构（不限数量），另一半收归国有。所有持有股票者均依此类推。
+"Will it enter our waters?"
 
-　　目前的所有利益分配，均以点券计算。除非特殊情况，个人不能增持股票。
+"Let's put it this way, I believe their destination is not Vietnam at all, but very likely mainland China!"
 
-　　至于某些春心萌动，已经提出穿越国是否能提供多子女补贴的人士，执委会的回答的是等你们有了子女再说。福利问题过于复杂，目前无法太多的归化。
+"And they were in frequent contact with the Transmigration Company you investigated last time!" the section chief added.
 
-　　总得来说，大家对整套政体和分配制度比较满意，会后，每个人都领取到了他的股票证——这是执委会在本地一家印刷厂花大钱定制的，钞票纸一般挺贵的手感，蓝色的油墨，复杂无比的花纹，中心图案是一艘在朝日下乘风破浪的海船，上面还印刷有持有人的姓名、代码和流水条形码——以便遗失损毁的时候补办。执委会还特意每张证都配发了一个带挂绳的塑料防水袋。
+Guo Yi's head buzzed. *This is huge! Smuggling weapons and ammunition, and from the US to China? The nature of this case is serious.*
 
-　　“20万股，靠，不知道以后能分多少红利。养4－5个老婆总够了吧？”
+The department agreed to let the two American agents accompany them as observers to provide assistance. Guo Yi, holding the materials, returned to his office in a daze. It felt a bit like being drunk—both apprehensive and expectant. If he could solve this case, it would be a great merit.
 
-　　“没出息啊，这点红利算个啥。”[吴南海][y009]把股票证塞近防水袋里，“我希望我死后，有几十个孩子来争打遗产官司！”他满怀豪情地望着21世纪的天空——在17世纪的天空下，[吴南海][y009]——这位农大毕业的宅男将满足他的赫赫野心。
+"Hello, let's start as soon as possible," said the Chinese-American agent named Xue Ziliang, who spoke fluent Mandarin.
 
-　　中秋节假日刚过的第一个周六，郭逸刚刚起床，手机就响了起来。
+In the conference room, Xue Ziliang and his partner introduced some of the suspicious circumstances they had uncovered.
 
-　　电话是科长打来的：
+"There are five Chinese men, two Chinese women, one Latina woman, and one young Chinese girl on the boat."
 
-　　“小郭，你上次侦察的那个穿越公司——”
+He handed Guo Yi a folder containing photos and personal information of each person.
 
-　　“是！我上交过相关报告了。”
+"According to our investigation, there are two families on board, one of which has a child. The Latina woman seems to be the girlfriend of one of the Chinese men. However, we are not very clear, because we don't even know her name."
 
-　　“这家公司有问题，限你20分钟内到办公室。”说完科长就挂掉了电话。这让郭逸吓出了一身冷汗——有问题这话不是随便说的，说有问题就是有了很大的问题。
+Guo Yi was a bit baffled. Was this a combination for arms smuggling? It wasn't strange to have women, but why a child?
 
-　　18分钟赶到办公室，办公室里除了科长还有本机关外事部门的一位领导带着一男一女两个外国人。女的金发碧眼，男的虽然是黑发黑眼的纯种中国人长相，凭他多年来的工作经验一看就知这是个ABC。这两个外国人看上去身手矫健，十有八九是在强力部门服务的工作人员。
+Seeing his confusion, Xue Ziliang said:
 
-　　“这位是薛子良，这位是他的搭档萨琳娜。”科长介绍着，“他们是USA烟酒火器管理局的外勤工作人员。半个月前，该局发出一份通报来，有多名中国籍男子将大批枪械弹药运抵夏威夷，并在该州租用了一艘100吨级游艇后离港，所办航海手续为前往越南。他们怀疑，这些枪械弹药正在该船上。”
+"We believe they may be using a family sailing trip as a cover for some illegal smuggling trade." He told Guo Yi that in the past month, the ATF had discovered these people were buying large quantities of firearms, mainly SKS semi-automatic rifles, and ammunition. The quantity was astonishing, far exceeding the needs of a normal gun enthusiast. Moreover, they already owned a considerable number of private firearms. To purchase hundreds more weapons was not a common behavior for Chinese-Americans in the US—their motives were clearly not good.
 
-　　“会进入我国海域么？”
+"So you think it's appropriate for white Americans to do this?" Guo Yi took great offense at this last sentence. *You banana, you don't even know what color your own skin is!*
 
-　　“这么说吧，我认为他们的目的地根本不是越南，很有可能是中国大陆！”
+"No, no, that's not what I meant." Xue Ziliang was a bit flustered. The issue of race was always a sensitive topic in the United States. "I mean, this is not in line with the behavioral habits of the Chinese-American community. I am not denying that they enjoy the rights granted by the US Constitution..." Eager to change the subject, he quickly continued, "There is also a person with a prior record among them." He pointed to a page in the folder. The photo showed a square-faced Chinese man with graying hair. "This person is named Lin Chuanqing. He was once a snakehead in a human smuggling ring and is familiar with the smuggling routes from the United States to the South China Sea. With him at the helm, we have to doubt their true destination!"
 
-　　“而且他们和你上次调查过的穿越公司一度联系很频繁！”科长补充了一句。
+"Besides the phone calls, are there any other suspicious points that can be linked to the Transmigration Company?"
 
-　　郭逸的脑袋轰的一声——这还了得，走私武器弹药，还是从美国走私到中国来？这案子的性质可严重了。
+"We don't know who they were contacting. It was only when we came to your department that we learned those numbers belonged to the 'Transmigration Company' and related personnel. We made inquiries back home and found that one of the five men had returned to China seven months ago. The port of entry was Guangzhou. Here is his file."
 
-　　部门里同意这两个美国特工以观察者的身份随行提供办案协助，郭逸拿着材料晕乎乎的回到自己的办公室，这感觉有点象醉酒了——即忐忑又期待。这案子，办下来可就是大功了。
+Guo Yi glanced at it. Shi Niaoren. What a strange name. His profession was a doctor, specializing in infectious diseases. Would such a scholarly-looking middle-aged man be involved in arms smuggling?
 
-　　“你好，我们尽快开始吧。”叫薛子良的华裔特工说道，此人操着一口流利的普通话。
+Guo Yi made phone calls, checked files, and on the way, asked the general affairs section to bring some instant coffee—these two Americans showed no intention of resting. It looked like they were in for a long haul.
 
-　　在会议室里，薛子良和他的搭档介绍了他们侦察到的一些可疑情况。
+The result of his call to the local department startled Guo Yi: the Transmigration Company had terminated their lease two weeks ago! The base was now empty, except for two clueless old gatekeepers. There was no one left.
 
-　　“船上共有华裔男子五人，华裔女子二人，拉丁裔女子一人，华裔女幼童一人。”
+Where did they go? After a flurry of phone calls, he finally learned from the highway administration that several vehicles registered to the Transmigration Company had gone via the expressway to a county on the Leizhou Peninsula—a county that happened to have a port!
 
-　　他递给郭逸看文件夹，里面是每个人的照片和个人资料。
+A port? Could it be the rendezvous point? Then there must be a ship! Guo Yi's thoughts turned to this. Suddenly, he recalled his solo reconnaissance of the training base: the base had a harbor, and there were small boats in the harbor...
 
-　　“根据我们的调查，船上有二个家庭，其中一个家庭有儿童。拉丁裔女子似是其中一名中国籍男子的女友。不过我们并不是很清楚，因为我们连她叫什么都不知道。”
-
-　　郭逸有点莫名其妙，有这样的军火走私组合吗？有女人不稀罕，怎么还有儿童？
-
-　　看出了他的疑惑，薛子良说：
-
-　　“我们认为他们可能是以家庭航海为名，进行某些不法的走私贸易行为。”他告诉郭逸，烟酒火器管理局在最近一个月里发现这些人在大量购入以SKS半自动步枪为主的火器和子弹，数量十分惊人，远远超过了正常枪械爱好者的需求。而且他们本身已经拥有了数量不少的私人枪支，再购入上百的武器，美国的华裔很少有这样的举动——其动机显然不良。
-
-　　“那你觉得美国白人有这样的举动就是合适的了？”郭逸对这最后一句有了极大的反感，你个香蕉，都不知道自己的皮肤是啥颜色的了！
-
-　　“不，不，我不是这个意思。”薛子良有点狼狈，种族问题在美国向来是比较敏感的话题，“我的意思是，这不大符合华裔族群的行为习惯，并不否认他们享有美国宪法所赋予的权力……”为了急于岔开话题，他赶紧说了下去，“这里面还有一个人是前科的。”他指了一下文件夹里的一页纸，照片上的华裔男人国字脸，花白头，“此人叫林传清，曾经是偷渡集团的蛇头，熟悉美国至南中国海的偷渡路线。由他驾船，我们不得不怀疑其真实目的地！”
-
-　　“除了电话之外，还有什么其他可疑点能够和穿越公司联系起来吗？”
-
-　　“我们并不清楚他们是在和谁联系，只是到了你们部门才得知道那些号码是‘穿越公司’和相关人士的，我们电询了国内，查出这五名男子中，有一人曾在七个月前回过中国，入境口岸是广州。这是他的材料。”
-
-　　郭逸看了一眼，时袅仁，这个名字好怪，看职业是医生。还是传染病方面的。这么个白面中年男会去走私军火？
-
-　　郭逸打电话，查资料，顺路还叫总务科拿点速溶咖啡来——这两个美国佬一点休息的意思也没有，看起来要大干一场了。
-
-　　给当地部门打电话的结果吓了郭逸一跳：穿越公司在半个月前就退租了！基地里如今人去楼空，除了两个一无所知的看门老头，一个人都没有了。
-
-　　去向呢？一阵狂打电话之后，终于从高速公路管理部门了解到。穿越公司名下的多辆汽车经高速公路去了雷州半岛的某个县——这个县，正好有一个港口！
-
-　　港口？难道是接应的地点？那么一定得有船了！郭逸的思路转到了这里，忽然他联想起来那天他独探训练基地：基地是有港湾的，港湾里还有小艇……
-
-　　他马上开始拨打电话。
+He immediately started making phone calls.
 [y009]: /characters/y009 "吴南海"
