--- a/_posts/2009-10-17-1-04700.md
+++ b/_posts/2009-10-17-1-04700.md
@@ -1,154 +1,154 @@
 ---
 layout: post
-title: 第四十七节 前夜
+title: "Section 47: The Eve"
 category: 1
 path: 2009-10-17-1-04700.md
 tag: [normal]
 ---
 
-　　黄昏的天空一片静谧的晕黄色，远处天幕上的浮云镶嵌着淡淡的金边。傍晚的海风微微吹拂，丰城轮平稳的行驶着，琼州海峡的天气很好，浪高不到1.5米，即使没什么坐船经历的人，也没有晕船的感觉。
+The evening sky was a tranquil, hazy yellow, the floating clouds on the distant horizon edged with a faint golden light. The evening sea breeze blew gently. The *Fengcheng* sailed steadily. The weather in the Qiongzhou Strait was excellent, with waves less than 1.5 meters high. Even those with little experience on boats did not feel seasick.
 
-　　巨大的船首劈开浪花，乘风破浪。以背包客名义搭船的穿越者们三三两两的或坐或站在甲板上，眺望着海峡两侧的风景。琼州海峡是很狭窄的一条水道，从船上就可以看得到北面的雷州半岛和南面的海南岛的海岸线。
+The huge bow cut through the waves, riding the wind. The transmigrators, who had boarded as backpackers, were sitting or standing on the deck in small groups, gazing at the scenery on both sides of the strait. The Qiongzhou Strait is a very narrow waterway; from the ship, one could see the coastlines of the Leizhou Peninsula to the north and Hainan Island to the south.
 
-　　在船的侧面不到20链的地方，一艘矮墩墩的平甲板驳船正紧随其后，甲板上满载集装箱和各种车辆机械。两船都是以10节的速度前进，他们的预计在北京时间6点和从另一个港口开出的四艘渔船汇合。
+Less than 20 cable lengths to the side of the ship, a squat, flat-deck barge followed closely, its deck fully loaded with containers and various vehicles and machinery. Both ships were proceeding at a speed of 10 knots. They were scheduled to rendezvous at 6:00 PM Beijing time with four fishing boats that had set out from another port.
 
-　　经过蒙德半个来月的奔波，终于完成了复杂的装货过程，沿海货轮本来就是什么都装的角色，倒也没引起港务部门的诧异，唯一觉得不可思议的是油料公司——两艘船居然全部用的是柴油，而不要廉价的船用重油。
+After more than half a month of hard work by Meng De, the complex loading process was finally completed. Coastal freighters were used to carrying all sorts of cargo, so it didn't arouse any suspicion from the port authorities. The only thing the fuel company found incredible was that both ships were using diesel fuel instead of the cheaper heavy fuel oil for ships.
 
-　　雇佣的船员是菲律宾人。古怪的英语除了蒙德这个经常在港口混饭的人之外没人能够明白——好处是他们毫不在意船上装的是什么，那些穿着绿作训服的背包客又怎么来了这么多——三分之二的穿越者都集中在这艘船上。只有少数专业人员安排在其他船只上。
+The hired crew were Filipinos. Their strange English, apart from Meng De who often hung around the port for work, was incomprehensible to everyone else. The advantage was that they were completely indifferent to what was loaded on the ship, or why there were so many backpackers in green training uniforms—two-thirds of the transmigrators were concentrated on this ship. Only a few professionals were assigned to the other vessels.
 
-　　整个货轮上其实没给穿越者们留下多少空间，五个货舱全部都装满了货物，连甲板上都捆了若干集装箱。有几个动物货柜还不断散发着恶臭。除了妇女儿童能分配到船员的房间外，多数人只能坐在甲板上，等待着命定的一刻来临。
+There wasn't much space left for the transmigrators on the freighter. All five cargo holds were filled with goods, and even the deck was strapped with several containers. A few animal containers constantly emitted a foul stench. Except for the women and children who were assigned to the crew's cabins, most people could only sit on the deck, waiting for the destined moment to arrive.
 
-　　好在大家还处在一种即将开创新时代的兴奋中，并没有感到太多的不便。有些人昨天没有睡好，这会干脆在甲板上铺开了睡袋补起觉来，也有临风而站，望着若隐若现海南岛的海岸线。他们在这个时空出生、成长，原本也将在这里终老。凝聚着无数的爱与恨，失望与满足，无数人生的第一次——他们即将离开这里，永远也不再回来，如同死亡的永别一样。
+Fortunately, everyone was still in a state of excitement about creating a new era and didn't feel too much inconvenience. Some people hadn't slept well the previous night and were now catching up on sleep in their sleeping bags on the deck. Others stood against the wind, gazing at the faint coastline of Hainan Island. They were born and raised in this time-space, and they were originally supposed to grow old and die here. It held countless loves and hates, disappointments and satisfactions, and countless firsts in their lives. They were about to leave this place, never to return, a farewell as permanent as death.
 
-　　站在尾楼上的执委会成员们可没有这样的闲情逸致来感慨这一历史性的时刻。根据计划，从渔港出发的渔船和登陆艇，以及传说中的北美分舵的游艇应该在下午17时和他们汇合，此时他们不断的用望远镜搜索海面，看到的只是三三两两正在归航的沿海渔船。
+The members of the Executive Committee standing on the sterncastle had no such leisure to feel sentimental about this historic moment. According to the plan, the fishing boats and landing craft from the fishing port, as well as the legendary yacht from the North American branch, were supposed to rendezvous with them at 17:00. At this moment, they were constantly scanning the sea with binoculars, but all they saw were a few coastal fishing boats returning to port.
 
-　　北美分舵的游艇提前十分钟第一个抵达，蓝白相间的艇身张满了雪白的三角帆，从海面上优雅的滑过，引起了穿越众们一阵欢呼和口哨声。执委会的望远镜里可以看到时袅仁正在甲板上挥舞双手，船帆下面的舱口又爬出个张着大大的眼睛，一脸迷惑的外国女人——显然她不明白这是在干嘛。
+The North American branch's yacht was the first to arrive, ten minutes early. Its blue and white hull, with full white triangular sails, glided gracefully across the sea, drawing a round of cheers and whistles from the transmigrators. Through the Executive Committee's binoculars, they could see Shi Niaoren waving his hands on the deck. From a hatch below the sail, a foreign woman with large, bewildered eyes climbed out—she clearly had no idea what was going on.
 
-　　“这妞身材不错啊。”[王洛宾][y003]端着望远镜喃喃自语。
+"This chick has a nice figure," [Wang Luobin][y003] muttered to himself, holding the binoculars.
 
-　　“栗色长发，不是大洋马啊。”
+"Chestnut-colored long hair, not a blonde Westerner."
 
-　　“你懂什么，这是拉丁裔的，又不是金发碧眼才能叫洋马。”
+"What do you know? She's Latina. Not only blondes can be called Western chicks."
 
-　　十多只望远镜注视着新出现的尤物。全然不顾北美的全体男淫正在甲板上挥手致意。
+A dozen or so binoculars were fixed on the newly appeared beauty, completely ignoring the men from the North American branch who were waving from the deck.
 
-　　渔船和登陆艇依然迟迟不露面幸好无线电一直保持着联系。四艘渔船因为负责拖带多个大型浮动筏——这活谁也没干过，光调整拖缆长度就浪费了好几个小时——终于在下午17时过20分钟的时候，与已经等待多时的轮船汇合。
+The fishing boats and landing craft were still nowhere to be seen, but fortunately, they maintained radio contact. The four fishing boats were responsible for towing several large floating rafts—a task no one had ever done before. Just adjusting the length of the tow cables had wasted several hours. They finally rendezvoused with the waiting ships at 17:20.
 
-　　这支奇怪的船队就这样沿着海南岛的海岸线低速前进，博铺港已近在咫尺，临近夜幕降临，港湾内的灯光已经明灭可辨。航线上的船舶也都亮起了航行灯。
+This strange fleet thus proceeded at low speed along the coastline of Hainan Island. Bopu Port was close at hand. As night approached, the lights in the harbor were faintly discernible. The ships on the shipping route had also turned on their navigation lights.
 
-　　“GPS显示，我们现已在博铺港以北偏东3海里处。”
+"GPS shows we are now 3 nautical miles northeast of Bopu Port."
 
-　　“减速，打开全部灯光！”
+"Reduce speed, turn on all lights!"
 
-　　“接管船只！”
+"Take over the ship!"
 
-　　“各船向旗舰靠拢！”
+"All ships, approach the flagship!"
 
-　　“准备虫洞！”
+"Prepare for wormhole!"
 
-　　随着一声声的命令，蒙德首先以船东的身份将船员全部集中到甲板上，随即军事组的成员亮出他们的五连发猎枪。没费任何口舌，20多名船员非常合作的下到一艘专门为其准备的救生艇上，向岸边划去。
+With a series of commands, Meng De, in his capacity as the shipowner, first gathered all the crew members on the deck. Then, members of the military group revealed their five-shot shotguns. Without any argument, the 20-odd crew members very cooperatively boarded a specially prepared lifeboat and rowed towards the shore.
 
-　　此时各艘船上的全部灯光都开了，轮船上的探照灯照得甲板一片雪亮，穿越者们意识到历史性的一刻即将到来，纷纷站了起来，睁大了眼睛望着尾楼。
+At this time, all the lights on every ship were turned on. The searchlights on the freighter illuminated the deck as bright as day. The transmigrators realized that the historic moment was about to arrive. They all stood up, their eyes wide, staring at the sterncastle.
 
-　　高音喇叭里响起了试音的喂喂声，接着，传来了一个高亢的有点过分的男声：
+The high-powered speakers crackled with a test sound, and then a high-pitched, almost excessive male voice came through:
 
-　　“注意，穿越五分钟准备！全体人员穿救生衣，进舱！”
+"Attention, five minutes to transmigration! All personnel, put on life jackets and get inside the cabins!"
 
-　　估计到虫洞在穿越时会因为能量的剧烈波动而产生振荡，为了防止万一有人落水，除了必要的甲板人员系上安全绳坚守岗位，所有人都挤进了船舱里，接着，水密门也都关上了。
+Anticipating that the wormhole would oscillate due to intense energy fluctuations during the transit, to prevent anyone from falling overboard, all personnel except for essential deck crew, who were secured with safety ropes, squeezed into the cabins. Then, the watertight doors were sealed.
 
-　　“[文总][y002]，开始吧！”蒙德紧张地站在操舵的位置上。
+"[Director Wen][y002], let's begin!" Meng De said, standing nervously at the helm.
 
-　　“好，开始。”
+"Alright, begin."
 
-　　随着被悬在船头的虫洞慢慢的被船首挤开，这个巨大的镜面闪烁着前所未有的光芒，照亮了周围的一大片海域。虫洞的边缘如焰火一般散射着能量的光芒。
+As the wormhole, suspended at the bow of the ship, was slowly pushed open by the ship's prow, the huge mirror-like surface shimmered with an unprecedented brilliance, illuminating a large area of the surrounding sea. The edges of the wormhole scattered a firework-like glow of energy.
 
-　　“坚持住。”[文德嗣][y002]嘀咕了一声，心里暗暗起到这玩意可别突然就爆了，不能去另一个时空还是小事，万一来个能量大爆炸，估计威力也不会比原子弹小多少吧。
+"Hold on," [Wen Desi][y002] muttered, secretly praying that this thing wouldn't suddenly explode. Failing to get to the other time-space was a small matter; if there was a massive energy explosion, the power probably wouldn't be much less than an atomic bomb.
 
-　　“各船注意！”蒙德吼了一声，“缩短间距，全速通过虫洞！全体准备接受冲击！”
+"All ships, attention!" Meng De roared. "Shorten the distance, full speed through the wormhole! All hands, prepare for impact!"
 
-　　船舱里的穿越众可不知道外面还有这么一出。都一脸严肃的紧抓身边的固定物等待传说中的穿越冲击波。忽然，灯光疯狂的闪烁起来，所有人的脸和手都好像过了一层静电，微微的发麻。一阵怪异的头晕目眩感涌了上来。
+The transmigrators in the cabins had no idea what was happening outside. They all gripped nearby fixed objects with serious expressions, waiting for the legendary transmigration shockwave. Suddenly, the lights flickered wildly. Everyone's face and hands felt a slight tingle of static electricity. A strange wave of dizziness washed over them.
 
-　　“穿了！”有人喊道。
+"We're through!" someone shouted.
 
-　　没有人呼应他，许多人在灯光闪烁的瞬间闭起了眼睛。
+No one responded. Many had closed their eyes the moment the lights flickered.
 
-　　当殿后的渔船通过虫洞后没多久，本来像镜面一样反射出货船上的灯光的虫洞通道突然开始发光，短短数秒时间从一个平面膨胀成一个发出刺眼强光的球体，然后……消失了！海水飞速回灌进虫洞留下的50多米直径的海水空洞，奔泻而下的海水撞击在一起又冲到10多米高的空中发出巨鼓一般的响声，离开虫洞一百多米的船队殿后的渔船被4－5米高的浪头无情的洗礼了一次。幸好准备工作充分，没有任何的损失。
+Not long after the last fishing boat passed through the wormhole, the portal, which had been reflecting the lights of the freighter like a mirror, suddenly began to glow. In just a few seconds, it expanded from a flat plane into a blindingly bright sphere, and then... it vanished! Seawater rushed back into the 50-meter-diameter void left by the wormhole. The cascading water crashed together and shot up more than 10 meters into the air with a sound like a giant drum. The last fishing boat in the fleet, over a hundred meters away from the wormhole, was mercilessly washed over by a 4-5 meter high wave. Fortunately, the preparations were thorough, and there were no losses.
 
-　　“各船汇报状态！”蒙德在电台里喊道。
+"All ships, report status!" Meng De shouted into the radio.
 
-　　“驳船正常！”
+"Barge, normal!"
 
-　　“登陆艇正常！”
+"Landing craft, normal!"
 
-　　“渔1正常！”
+"Fishing 1, normal!"
 
-　　“渔2正常！”
+"Fishing 2, normal!"
 
-　　“渔3正常！”
+"Fishing 3, normal!"
 
-　　“渔4正常！”
+"Fishing 4, normal!"
 
-　　“北美，正常……啊，有一艘汽艇在急速靠近我艇！”
+"North America, normal... ah, there's a motorboat approaching my vessel at high speed!"
 
-　　执委会的人都是心头一沉，汽艇，17世纪哪来的汽艇？
+The hearts of the Executive Committee members sank. A motorboat? Where would a motorboat come from in the 17th century?
 
-　　不等[文德嗣][y002]说话，席亚洲已经在通话器里呼叫渔船舰队的领队邬德了。
+Before [Wen Desi][y002] could speak, Xi Yazhou was already calling Wu De, the leader of the fishing boat fleet, on the communicator.
 
-　　“老邬，你赶快带人去北美船上支援。”
+"Old Wu, take your men to the North American boat to provide support, quickly."
 
-　　“明白！”
+"Understood!"
 
-　　随后丰城轮打开了两个大型探照灯，雪亮的光芒顿时照亮了夜幕已经降临的海面，邬德率领的渔船舰队中的两艘船离开编队，船首劈开波浪，一南一北的全速向帆船两翼包抄过去。
+Subsequently, the *Fengcheng* turned on its two large searchlights. The bright beams instantly illuminated the sea, which was now under the cover of night. Two of the boats from Wu De's fishing fleet broke away from the formation, their bows cutting through the waves, and moved at full speed to flank the sailboat from the south and north.
 
-　　灯光照亮了整个水域，[文德嗣][y002]在望远镜里看到了正靠近北美帆船旁的汽艇，载客8人的小型的海用摩托艇而已——是他们也穿了，还是自己根本没穿过去？
+The lights illuminated the entire area. In his binoculars, [Wen Desi][y002] saw the motorboat approaching the North American sailboat. It was just a small, 8-passenger recreational motorboat. *Did they come through with us, or did we not transmigrate at all?*
 
-　　他看了一眼身边的人，发现执委会的每个人都沉着脸，显然他们的想法是一样的。
+He glanced at the people around him and saw that every member of the Executive Committee had a grim expression. Clearly, they were all thinking the same thing.
 
-　　执委会的人几乎年龄都在三十以上，个个自诩多年社会磨砺，沉着冷静是起码的修养。但这会也渐渐沉不住气了。虫洞已经没了，如果没穿过去，不用说是一场灾难了。
+Most of the Executive Committee members were over thirty, and they all prided themselves on their years of social experience, with composure being a basic quality. But at this moment, they were gradually losing their cool. The wormhole was gone. If they hadn't transmigrated, it would be nothing short of a disaster.
 
-　　蒙德拼命拿着望远镜察看着四面，水面上看不到月亮，四处一片漆黑，只有以这艘丰城轮为中心的海域是灯火辉煌，这更让四周的黑暗变得深不见底。
+Meng De desperately scanned the surroundings with his binoculars. The moon was not visible on the water's surface. It was pitch black all around, except for the brilliantly lit area centered on the *Fengcheng*. This only made the surrounding darkness seem more bottomless.
 
-　　“应该是过来了吧。”他嘀嘀咕咕的自言自语，忽然想起了什么，赶紧察看起设备来。
+"We should be over, right?" he muttered to himself. Suddenly remembering something, he quickly began to check the equipment.
 
-　　“GPS没信号了！”他叫了起来。
+"No GPS signal!" he shouted.
 
-　　这个举动也提醒了其他人，好几个人都掏出了手机——“信号搜索中”——琼州海峡里手机信号应该是正常的。
+This action also reminded the others. Several people pulled out their mobile phones—"Searching for signal." In the Qiongzhou Strait, mobile phone signals should be normal.
 
-　　电台里的各个频率也都是一批空白，只有电流的回波的嘶叫声。
+All the radio frequencies were also blank, with only the hiss of static.
 
-　　“成功了！”执委会委员们把冷静抛之一旁，欢呼起来。
+"We succeeded!" The Executive Committee members threw their composure aside and cheered.
 
-　　既然这里是17世纪，不管汽艇上来的是何许人也，都无碍大局了。
+Since this was the 17th century, no matter who was on that motorboat, it wouldn't affect the overall situation.
 
-　　电台里传来了邬德的声音：“已经控制全船，俘虏4人。好像是旅游者。”
+Wu De's voice came over the radio: "We have control of the entire boat, four captives. They seem to be tourists."
 
-　　“全部送旗舰上来。”
+"Bring them all to the flagship."
 
-　　夜还漫长，黑灯瞎火的靠近海岸显然是冒险的行为。执委会决定所有船只就地下锚，等天亮后再进行登陆行动。这里是17世纪，没什么船会有能力碰撞损害到他们。为了安全起见，各船的大灯都打开了照得周围雪亮。军事组人员已经从北美帆船上开启了一批枪枝，分配到各船上。现在他们即有武器又有人，什么也不怕。
+The night was still long, and approaching the coast in the dark was obviously a risky move. The Executive Committee decided that all ships would anchor where they were and wait for daylight before proceeding with the landing. This was the 17th century; no ship had the ability to collide with and damage them. For safety, the floodlights on all ships were turned on, illuminating the surroundings brightly. The military group had already retrieved a batch of firearms from the North American sailboat and distributed them to each ship. Now they had both weapons and men; they were afraid of nothing.
 
-　　“格老子，你们这是干什么！土匪！海盗！二流子！棒棒！”[萧子山][y001]刚一打开门，就听到一个中气十足的老人的吼叫声。
+"What the hell are you doing! Bandits! Pirates! Hooligans! Bums!" The moment [Xiao Zishan][y001] opened the door, he heard the full-throated roar of an old man.
 
-　　“爸，您别喊了，有话好说……”另一个男声在劝阻。
+"Dad, don't shout. We can talk this out..." another male voice tried to dissuade him.
 
-　　“这是琼州海峡，不是红海，索马里！人民海军不是吃素的！”
+"This is the Qiongzhou Strait, not the Red Sea or Somalia! The People's Navy is not to be trifled with!"
 
-　　“你们几位先生有话好说，我们是普通老百姓，不是有钱人，一家来海南旅游的……”这是个中老年妇女的声音。
+"Sirs, we can talk this out. We are ordinary people, not rich. We are just a family on vacation in Hainan..." This was the voice of a middle-aged woman.
 
-　　[萧子山][y001]下意识的拉了拉衣襟，正了下帽子——他很不习惯穿制服，推开舱门走了进去。
+[Xiao Zishan][y001] subconsciously straightened his collar and adjusted his hat—he was not used to wearing a uniform. He pushed open the cabin door and walked in.
 
-　　很快就弄清了。原来汽艇上的四个人是一家子：一对老夫妻和儿子儿媳。一家人去海南旅游，老头子过去曾经在海军部队服役多年，和海南这一圈的部队都熟悉。过海峡的时候没买船票，找部队里的老熟人借了一艘旧汽艇，想顺便温一下航海的旧梦。没想到快到博铺港这边的时候忽然遇到了奇怪的风暴，等平息下来四面一片漆黑，就看到不远处的那几艘船了，向帆船靠拢纯属是为了问个信——汽艇上除了罗盘之外什么航海设备也没有。结果莫名其妙的就被两艘渔船上的人给抓了。
+They quickly figured out the situation. The four people on the motorboat were a family: an elderly couple and their son and daughter-in-law. The family was on vacation in Hainan. The old man had served in the navy for many years and was familiar with the military units around Hainan. Instead of buying ferry tickets to cross the strait, he had borrowed an old motorboat from an old acquaintance in the military, hoping to relive his old sailing dreams. Unexpectedly, as they were approaching Bopu Port, they suddenly encountered a strange storm. When it subsided, it was pitch black all around. They saw the few ships in the distance and approached the sailboat purely to ask for information—the motorboat had no navigation equipment other than a compass. As a result, they were inexplicably captured by the people on the two fishing boats.
 
-　　“几位先休息一下吧。”[萧子山][y001]依然满面笑容，“现在外面天黑着，天亮了我们再说。”心想这事怎么说得清——人肯定当我安定医院逃出来的。
+"Please rest for a while," [Xiao Zishan][y001] said, still smiling. "It's dark outside now. We'll talk when it's light." He thought to himself, *How can I explain this? They'll definitely think I escaped from a mental hospital.*
 
-　　“天亮就让我们上岸吗？”公务员模样的儿子问道，[萧子山][y001]注意到他在整个谈话过程中不断的看他那漂亮的老婆。
+"Will you let us go ashore at dawn?" asked the son, who looked like a civil servant. [Xiao Zishan][y001] noticed that he kept looking at his beautiful wife throughout the conversation.
 
-　　“这位先生，我们真得就是老百姓而已啊。把我们扣着有什么用呢？”老太太又在解释了，虽然事情很突兀，现场又有几个凶神恶煞的大汉端着5连发猎枪，她还是镇定自若的解释着，说话一点不乱，一看就是场面上的人物。
+"Sir, we really are just ordinary people. What's the use of holding us?" the old woman explained again. Although the situation was abrupt and there were several fierce-looking men holding five-shot shotguns, she remained calm and composed, her speech clear. She was clearly a person of experience.
 
-　　“你看，不怕你笑话，我们家老头子过去就是在这里当海军的，儿媳妇也是干警察这行的，这海峡里海事、海监、海关、海警、渔政还有海军的船是川流不息的，你们这样有意义吗？都还是年轻人，犯不着这样。我们一家就是老百姓，也不想当英雄，下了船大家各归各，随身的行李就当是丢了……”
+"Look, you might laugh, but my old man used to be in the navy right here. My daughter-in-law is also in the police force. The ships of the maritime affairs, maritime surveillance, customs, maritime police, fisheries administration, and the navy are constantly patrolling this strait. Is there any point in you doing this? You are all still young; it's not worth it. We are just ordinary people and don't want to be heroes. Once we get off the boat, we'll go our separate ways. We'll consider our luggage lost..."
 
-　　老太太的话软中带硬，不错呀。比这儿子和媳妇强太多了。[萧子山][y001]依然礼貌地点点头，说：
+The old woman's words were soft but firm. Not bad. Much better than her son and daughter-in-law. [Xiao Zishan][y001] still nodded politely and said:
 
-　　“一切事情等明天再说吧。”他站起身来，“你们会看到，这是一个新的世界！”
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+"We will discuss everything tomorrow." He stood up. "You will see that this is a new world!"
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
 [y003]: /characters/y003 "王洛宾"
