--- a/_posts/2009-10-18-2-00100.md
+++ b/_posts/2009-10-18-2-00100.md
@@ -1,79 +1,79 @@
 ---
 layout: post
-title: 第一节 新世界
+title: "Section 1: New World"
 category: 2
 path: 2009-10-18-2-00100.md
 tag: [normal]
 ---
 
-　　天色微明的时候，丰城轮上的人已经纷纷走动起来。昨夜的一切，特别是虫洞消失瞬间的壮观场面，成了大家无穷无尽的话题，多数人在舱房内没看到这一幕，但是拍下画面的DV和数码相片却不少。
+As the sky began to lighten, the people on the *Fengcheng* were already stirring. The events of last night, especially the spectacular scene of the wormhole's disappearance, became an endless topic of conversation. Most people hadn't seen it from inside the cabins, but there was no shortage of DV footage and digital photos that had captured the moment.
 
-　　执委会还没有下令起锚开船，大家马上就发现了第一个在计划里没想到的问题，这么多人的早饭问题无法解决——船上的厨房是为40个船员准备的规模，现在仅仅丰城轮上就有400号人。更要命的是，盥洗也成了问题，厕所前排起了长队，有些等不及的人干脆就冒险跨到摇摇晃晃的小艇甲板上，直接向大海高空排泄起来。
+The Executive Committee had not yet given the order to weigh anchor and set sail, but everyone immediately discovered the first problem that hadn't been anticipated in the plan: feeding so many people for breakfast was impossible. The ship's galley was built for a crew of 40, but now there were 400 people on the *Fengcheng* alone. To make matters worse, washing up also became a problem. Long lines formed in front of the toilets. Some who couldn't wait any longer took the risk of climbing onto the swaying decks of the small boats tied alongside and relieving themselves directly into the sea.
 
-　　“马委员，这样不行的！”被任命为登陆侦察小队的队长北炜大光其火，跑到尾楼上冲着刚刚上任的登陆总指挥[马千瞩][y005]喊了起来，“这么多人的排泄物，会把鲨鱼都给引来了！这样登陆太危险了。”
+"Commissioner Ma, this won't do!" Bei Wei, the appointed leader of the landing reconnaissance team, was furious. He ran up to the sterncastle and shouted at [Ma Qianzhu][y005], the newly appointed landing commander. "All this human waste will attract sharks! It will make the landing too dangerous."
 
-　　[马千瞩][y005]无可奈何地说：“那我怎么办呢？船上的厕所只有那么10个位置，现在要400号人用。”
+[Ma Qianzhu][y005] said helplessly, "Then what do you want me to do? There are only 10 toilets on the ship, and now 400 people need to use them."
 
-　　“你不管，一会要出了事故就不好办了！鲨鱼不说了，都爬在那晃晃悠悠的小艇甲板上，摔下去一个连捞都不用捞。”
+"If you don't handle it, we'll be in big trouble if there's an accident! Never mind the sharks, they're all climbing onto the decks of those wobbly little boats. If one of them falls, we won't even need to bother fishing them out."
 
-　　正说着，管理食堂的[田大妈][y110]一脸无奈地走了进来：
+As they were speaking, "Auntie Tian" from the cafeteria management came in with a look of resignation.
 
-　　“马委员，您说这咋办呢？大伙说要喝点稀饭，我看船上那伙房，做不了四百个人的稀饭，来不及啊……”
+"Commissioner Ma, what should we do? Everyone wants to have some congee, but I looked at the galley on this ship, and it can't make congee for four hundred people. There's not enough time..."
 
-　　[马千瞩][y005]刚被北炜教育过，这会又有人扯起稀饭问题，眼看登陆计划还没开始就出了好几个纰漏，心里不耐烦起来：“这事情你找[萧子山][y001]啊，他不是你领导么！”
+[Ma Qianzhu][y005], having just been lectured by Bei Wei, now had someone else bothering him about congee. Seeing that the landing plan had already run into several hitches before it even began, he grew impatient. "Why are you bringing this to me? Go find [Xiao Zishan][y001]! Isn't he your superior?"
 
-　　“可是您不是登陆总指挥吗？这船上的事情都归您管啊。”
+"But aren't you the landing commander? Aren't all matters on this ship under your command?"
 
-　　还不都是你自己搞出来的事情！现在问我怎么办？[马千瞩][y005]心里暗暗骂了起来，但是又不便发作——人[田大妈][y110]五十多的人了，跟着穿越众舍生忘死的来开辟新世界——只好先敷衍一下，把皮球踢回去：“有多少先熬多少，一批批的发吧，有总比没有好……你再找[子山][y001]商量一下。”
+*Isn't this all a mess of your own making? And now you're asking me what to do?* [Ma Qianzhu][y005] cursed inwardly, but he couldn't show his anger—Auntie Tian was over fifty years old and had followed the transmigrators to risk her life and build a new world. He could only placate her for now, passing the buck back. "Cook as much as you can first, and distribute it in batches. Something is better than nothing... Go discuss it with [Zishan][y001]."
 
-　　不给大家熬稀饭本来也没什么：每个人都准备有二天分的干粮，只要保持淡水供应，啃啃那能量棒也能对付过去。
+Not making congee for everyone wouldn't have been a big deal. Everyone had been issued two days' worth of dry rations. As long as the fresh water supply was maintained, they could get by gnawing on those energy bars.
 
-　　问题是这[田大妈][y110]一看到船上有厨房，居然不管三七二十一的就按老习惯做上早饭了，天还没亮，总务组的[李元元][y007]带着几个女孩子给船楼里的执委会委员们端来了刚出锅的稀饭和蒸好的馒头，每人还有一小碟袋装咸菜和几颗油炸花生米。
+The problem was that as soon as Auntie Tian saw the ship had a galley, she had, without a second thought, started making breakfast according to her old habits. Before dawn, [Li Yuanyuan][y007] from the General Affairs Group had led a few girls to serve the Executive Committee members in the ship's superstructure freshly cooked congee and steamed buns, each with a small dish of pickled vegetables and some fried peanuts.
 
-　　这下[马千瞩][y005]就知道麻烦了，群众就是不患寡而患不均的，凭什么你们领导都在吃热腾腾稀饭馒头，俺们群众要就着凉水啃那过期月饼馅一般味道的能量棒？这事业的一开头，就搞出差别待遇来，人心一散，队伍就不好带了。所以这会执委会喝粥都偷偷摸摸的，没人靠近舷窗。他摸起电话：“轮机舱吗？把制淡设备开到最大，要充分保证淡水供应！”
+At that moment, [Ma Qianzhu][y005] knew there was trouble. The masses are not troubled by scarcity, but by inequality. Why should the leaders get to eat hot congee and steamed buns while the masses had to chew on energy bars that tasted like expired mooncake filling with cold water? To create such differential treatment at the very beginning of their enterprise would cause morale to plummet and make the group difficult to lead. So now, the Executive Committee was drinking their congee in secret, with no one daring to go near the portholes. He picked up the phone. "Engine room? Run the desalination equipment at maximum capacity. We must ensure a full supply of fresh water!"
 
-　　“充分保证，你谁啊？！”电话里传来一个愤懑不平的声音，“制淡设备就这点供应量，你叫我们尿淡水出来？”[马千瞩][y005]听出这个声音是萧白郎的，他是学机械加工专业，又会设备安装及管理，就给分配去跟船学习了三个月轮机。
+"Ensure a full supply? Who do you think you are?!" a resentful voice came from the phone. "The desalination equipment only has this much output. Do you want us to piss fresh water for you?" [Ma Qianzhu][y005] recognized the voice as Xiao Bailang's. He had a degree in mechanical processing and knew equipment installation and management, so he had been assigned to follow the ship for three months to learn about the engine room.
 
-　　目无领导！[马千瞩][y005]暗暗骂了一声，你个伪娘，看不我把你卖泰国去！心里发泄了一通，想呆这里也没用，干脆跟着北炜下甲板去。
+*Insubordination!* [Ma Qianzhu][y005] cursed silently. *You pretty boy, just you wait, I'll sell you to Thailand!* After venting his frustration internally, he realized it was useless to stay there. He might as well follow Bei Wei down to the deck.
 
-　　董时叶靠着自己的背包坐在甲板上，他从小艇甲板上下来的时候腿都软了，两腿之间就是大海，看一眼就够头晕了，幸亏船几乎没什么起伏，风平浪静的。天边的残月正在慢慢淡去，看着在厕所边排队边骂三字经的群众，他觉得这个险还是值得的。
+Dong Shiye sat on the deck, leaning against his backpack. His legs were weak when he came down from the small boat's deck. The sea was right between his legs, and just a glance was enough to make him dizzy. Fortunately, the ship was barely rocking; the sea was calm. The crescent moon in the sky was slowly fading. Watching the crowd queuing by the toilets, cursing, he felt the risk had been worth it.
 
-　　没地方洗手，还在他对这些问题早有准备，拿出消毒巾擦了擦——卫生纸，消毒巾、净水药片这些他带了很多——完全指望组织那是靠不住的。他也没拿出杯子去刷牙——许多人在船舷两侧不住做引吭高歌状，白色的泡沫在船体两侧挂出一条条污痕，蔚为壮观。他只用牙线和一片口香糖做了清洁牙齿的工作。尽量不打开整理完毕的背包，这就是他的原则。
+There was nowhere to wash his hands, but he had prepared for such problems long ago. He took out a disinfectant wipe and cleaned his hands. He had brought plenty of toilet paper, disinfectant wipes, and water purification tablets—it was unreliable to depend entirely on the organization. He didn't take out his cup to brush his teeth either. Many people were leaning over the ship's rails, spitting out white foam that left streaks on the hull, a spectacular sight. He just used dental floss and a piece of chewing gum to clean his teeth. His principle was to avoid opening his fully packed backpack as much as possible.
 
-　　执委会供应的稀饭一度让秩序有些混乱，董时叶可不去凑这个热闹——每次4大锅，只够40个人每人一碗。等的时间太长了。他也没去啃那难吃的能量棒，自己带着解放军单兵特种口粮，啃啃压缩干粮喝点水也就是了，喝粥一会还得找水洗盘子，要不洗的话盘子就成了细菌滋生的培养基了。
+The congee supplied by the Executive Committee caused some chaos for a while. Dong Shiye didn't join the crowd—each batch of four large pots was only enough for 40 people to have one bowl each. The wait was too long. He didn't bother with the disgusting energy bars either. He had his own PLA special forces rations. Chewing on compressed biscuits and drinking some water was enough. If he had congee, he would have to find water to wash the bowl later. If he didn't wash it, the bowl would become a breeding ground for bacteria.
 
-　　从船上看出去，昨天漆黑一团的海岸线现在已经清晰可辨。临高应该是一个已经开发的很成熟的县了，但是海岸的这一带，却像是没有人烟。
+Looking out from the ship, the coastline that had been a pitch-black mass yesterday was now clearly visible. Lingao in the 21st century was supposed to be a well-developed county, but this stretch of coast looked uninhabited.
 
-　　侧舷外不远处的海滩很窄，满地都是黑色的碎石砾，一点没有印象中海南碧海银沙的感觉。后面是一块矮小的断壁，由于地震的石头断裂悬崖切成了许多大小不等，形状各异的缺口。有些地方有几处不陡的斜坡，可以通向断壁的顶端。
+The beach not far from the ship's side was narrow, covered with black gravel, not at all like the image of Hainan's turquoise sea and silver sand. Behind it was a low cliff, fractured by an earthquake into numerous gaps of various shapes and sizes. In some places, there were a few gentle slopes leading to the top of the cliff.
 
-　　往西看去，距离丰城轮不到一海里的地方，有一个突出陆地的海角，那个大概就是博铺港的河口了，海角上长满了许多向水面倾斜的红树林。这些红树林郁郁葱葱，几乎长满了整个海岸地区一直延伸到水里。这个地方如果来得是一位植物学家，肯定会高兴的跳起来——这么完整的红树林生态圈在21世纪的海南已经很少能看到了。
+Looking west, less than a nautical mile from the *Fengcheng*, there was a cape jutting out from the land. That was probably the estuary of Bopu Port. The cape was covered with mangrove trees leaning towards the water. These lush mangroves covered almost the entire coastal area and extended into the water. If a botanist had come to this place, they would surely have jumped for joy—such a complete mangrove ecosystem was rarely seen in 21st-century Hainan.
 
-　　董时叶忽然发觉了一个奇怪的现象，就是这些沿海的树木里，竟然没有一棵海南最常见的椰子树！这让他这位老驴友十分诧异。椰子树是一种比较容易成活的树木，热带亚热带海岛、海岸上到处可见。他不知道临高本地原先的确是没有椰子树的——21世纪的临高椰子树是在上个世纪30年代以后才陆续引种的。
+Dong Shiye suddenly noticed a strange phenomenon: among all these coastal trees, there was not a single coconut tree, the most common tree in Hainan! This greatly surprised him, an experienced backpacker. Coconut trees are relatively easy to grow and can be seen everywhere on tropical and subtropical islands and coasts. He didn't know that Lingao originally had no coconut trees—the coconut trees in 21st-century Lingao were introduced successively after the 1930s.
 
-　　海滩上，起落飞翔着大群的叫声刺耳的海鸟。其中多数是各种不同的海鸥，也有潜鸟。显然，在21世纪很少能看到如此密集的鸟群，这荒莽的感觉让他的心情有些压抑——这里还是人类涉足极少的地方。
+On the beach, large flocks of screeching seabirds were taking off and landing. Most of them were various types of gulls, but there were also loons. It was clear that such a dense flock of birds was a rare sight in the 21st century. This sense of wilderness made him feel a little oppressed—this was a place where humans had rarely set foot.
 
-　　丰城轮右舷外一阵喧闹，由北炜带队首批登陆侦察队背着步枪、开山刀在同志们的注视下爬下舷梯，登上了摩托艇。
+A commotion arose on the starboard side of the *Fengcheng*. The first landing reconnaissance team, led by Bei Wei, slung their rifles and machetes over their backs and, under the watchful eyes of their comrades, climbed down the gangway and boarded a motorboat.
 
-　　登陆侦察队由军事人员、工程测绘人员、地质人员组成。他们的任务是探查港口及沿海数公里的地形、水文资料和可能有的村落及水源。配备了对讲机、自卫武器和25*8望远镜、测绘工具和一部300万象素DV。
+The landing reconnaissance team consisted of military personnel, engineering surveyors, and geologists. Their mission was to investigate the terrain, hydrography, and possible villages and water sources of the port and the coast for several kilometers. They were equipped with walkie-talkies, self-defense weapons, 25x8 binoculars, surveying tools, and a 3-megapixel DV camera.
 
-　　为了应付可能发生的意外，每个人都穿了防刺服，迷彩服和钢盔，执委会原打算把防暴服配备给他们，给北炜拒绝了——这东西虽然防护效果一流，穿着活动起来实在有点吃力。
+To deal with possible accidents, everyone wore anti-stab vests, camouflage uniforms, and steel helmets. The Executive Committee had originally intended to equip them with riot gear, but Bei Wei refused—although the protective effect was first-class, it was too cumbersome to move around in.
 
-　　“要注意安全！”[马千瞩][y005]在舷梯口对北炜说。
+"Be careful!" [Ma Qianzhu][y005] said to Bei Wei at the top of the gangway.
 
-　　“您放心好了。”北炜转身下了摩托艇。
+"Don't worry," Bei Wei replied, turning and descending to the motorboat.
 
-　　“突突……”的引擎声比现实里早了几百年打破了千万年的平静。摩托艇划开海浪快速驶向隐隐现现的海岸线。
+The "putt-putt..." of the engine broke millennia of silence several centuries ahead of its time. The motorboat cut through the waves and sped towards the faint coastline.
 
-　　北炜是登陆队的队长，全权负责登陆的安全事宜。登陆指挥部的给他的命令是，以搜集资料为主，避免与当地人发生武装冲突。如果能接触到人，则设法询问当地状况。为此特意把熊卜佑也安排进了侦察队——按理说这个漫画公司出身的宅男是不该出现在这样的首批侦察队里，但是他会说临高话，在队伍里是翻译官的角色。
+Bei Wei was the captain of the landing team, with full authority over the safety of the landing. The order from the landing command was to focus on gathering information and to avoid armed conflict with the locals. If they could make contact with people, they were to try to inquire about the local situation. For this purpose, Xiong Buyou was specially assigned to the reconnaissance team. Logically, this otaku from a manga company should not have been in such a first-wave reconnaissance team, but he could speak the Lingao dialect and served as the team's interpreter.
 
-　　临高话是海南方言中的异类，现代海南也只有临高、儋州和澄迈的一部分人使用。它不仅和普通话差异极大，和海南的主流方言琼州话也完全不同。一般认为，这种语言和广西的壮语有同源性。
+The Lingao dialect is an anomaly among Hainanese dialects. In modern Hainan, it is only used by some people in Lingao, Danzhou, and Chengmai. It is not only vastly different from Mandarin but also completely different from the mainstream Hainanese dialect, Qiongshan dialect. It is generally believed that this language shares a common origin with the Zhuang language of Guangxi.
 
-　　语言上的差异，使得临高在海南一直是一种特立独行的存在，与外界交流较少，社会环境相当的封闭。
+This linguistic difference has always made Lingao a unique and independent existence in Hainan, with little communication with the outside world and a very closed social environment.
 
-　　熊卜佑原来打算是穿他不惜耗费行李配重带来的锁子甲，但是这东西被北炜严词拒绝——太沉了，还是防刺背心比较实际一点。
+Xiong Buyou had originally planned to wear the chainmail he had brought at the cost of precious luggage weight, but Bei Wei had strictly forbidden it—it was too heavy. The anti-stab vest was more practical.
 
-　　侦察队因为依靠地图上的定位会有较大的误差——配备地图是虽然是最大比例的临高县地图、地形图。但是毕竟当中隔了四百年，很难说地形地貌的准确度有多少，纯属聊胜于无。因此北炜决定暂时不靠近海岸，直接朝向这里最显著的地形标记——临高角而去。
-[y001]: /characters/y001 "萧子山"
-[y005]: /characters/y005 "马千瞩"
+Because positioning based on the map would have a large margin of error—although the map they had was the largest scale map of Lingao County and its topography, it was still 400 years old, and it was hard to say how accurate the terrain was; it was better than nothing. Therefore, Bei Wei decided not to approach the coast directly for the time being, but to head straight for the most prominent geographical landmark here—Lingao Cape.
+[y001]: /characters/y001 "Xiao Zishan"
+[y005]: /characters/y005 "Ma千瞩"
 [y007]: /characters/y007 "李元元"
 [y110]: /characters/y110 "曹顺花"
