--- a/_posts/2009-10-19-2-00200.md
+++ b/_posts/2009-10-19-2-00200.md
@@ -1,119 +1,114 @@
 ---
 layout: post
-title: 第二节 临高角
+title: "Section 2: Lingao Cape"
 category: 2
 path: 2009-10-19-2-00200.md
 tag: [normal]
 ---
 
-　　如果说本时空的临高县是以什么样的方式最为广为人知，那就是“临高角”这个地方了。
+If Lingao County in this time-space was known for anything, it was the place called "Lingao Cape."
 
-　　1950年4月16日傍晚，第四野战军第十五兵团第四十军的一一八师和一一九师的一万八千七百多名人，在兵团副司令员兼四十军军长韩先楚、副军长解方的率领下，分乘318艘机帆船和32艘机动船，从雷州半岛的徐闻县灯楼角启航，渡过琼州海峡，以临高角灯塔为目标进发。次日凌晨三点多钟在临高角港湾登陆，揭开了海南岛战役的序幕。
+On the evening of April 16, 1950, more than 18,700 men of the 118th and 119th Divisions of the 40th Army, 15th Army Group of the Fourth Field Army, led by Deputy Army Group Commander and 40th Army Commander Han Xianchu and Deputy Army Commander Xie Fang, set sail from Denglou Cape in Xuwen County on the Leizhou Peninsula. They crossed the Qiongzhou Strait in 318 motorized junks and 32 motorboats, heading for the Lingao Cape lighthouse. At around 3:00 AM the next day, they landed in the bay of Lingao Cape, marking the beginning of the Hainan Island Campaign.
 
-　　另一个时空的临高角，还没有发生过这宏伟壮观的一幕，但这里一直以来都是海南岛的关津要地。于鄂水在出发前的情报通报会上特意指出，从元代开始临高角就设有烽火台。明代在这里设置有博铺巡检司，“提督盘诘之事”。正德年间这里有弓手三十人，巡船三只。到了万历末年，此地还有弓手十二人，估计最多有艘小船。不过此地向来是临高渔民的避风港，可能会遇到当地的渔船。
+In this other time-space, Lingao Cape had not yet witnessed this magnificent scene, but it had always been a strategic pass on Hainan Island. At the intelligence briefing before departure, Yu E'shui had specifically pointed out that Lingao Cape had a beacon tower since the Yuan Dynasty. In the Ming Dynasty, the Bopu Inspection Office was established here, tasked with "supervising and interrogating." During the Zhengde era, there were thirty archers and three patrol boats here. By the end of the Wanli era, there were still twelve archers and, at most, one small boat. However, this place had always been a haven for Lingao's fishermen, and they might encounter local fishing boats.
 
-　　北炜在船头仔细的搜索着前面的地形。D日到来之前的3个月，军事组的部分人员曾在21世纪的时空进行过一次海南的参谋旅行。对计划中登陆地点：临高角－博铺港以及作为候补的马袅湾、红牌湾、后水湾等地的地形做了重点勘察。
+Bei Wei carefully scanned the terrain ahead from the bow of the boat. Three months before D-Day, some members of the military group had conducted a staff tour of Hainan in the 21st century. They had focused their reconnaissance on the planned landing site—Lingao Cape and Bopu Port—as well as the alternate locations of Ma'niao Bay, Hongpai Bay, and Houshui Bay.
 
-　　北炜作为登陆侦察队的领队不仅当时详细的察看了地形，事后还多次根据资料重温了当地的地形地貌，以做到心中万无一失。
+As the leader of the landing reconnaissance team, Bei Wei had not only inspected the terrain in detail at the time but had also repeatedly reviewed the local topography and landforms based on the data afterward, to ensure he was completely prepared.
 
-　　东方际白，岸边的一切在望远镜中都显得非常清晰。汽艇此时已经进入了一个开阔的海湾，根据海图，这里应该是临高角西南的龙豪湾，因为风浪较小，鱼群经常会洄游到这里栖息，是临高的重要渔场之一。
+The east was turning white, and everything on the shore was very clear through the binoculars. The motorboat had now entered a wide bay. According to the nautical chart, this should be Longhao Bay, southwest of Lingao Cape. Because the waves were smaller here, schools of fish often migrated here to rest, making it one of Lingao's important fishing grounds.
 
-　　北炜用望远镜搜索着，很快就看到了熟悉的从西北延伸向东南，长约一公里的三角形海岬——没错，这里就是临高角。
+Bei Wei scanned with his binoculars and soon saw the familiar triangular cape extending from the northwest to the southeast, about a kilometer long—that's right, this was Lingao Cape.
 
-　　临高角在这里形成了一条天然的防波堤，长达1.5公里，宽500米。堤岸的中间都是海水冲上了的沙子，晶莹洁白，形成一条沙堤路。21世纪的海岬上有石砌的碉堡、了望塔和清朝海关在光绪十九年（1893年）建造的灯塔。本时空的堤岸上虽然空无一物，但是整个地貌差别很小。
+Lingao Cape formed a natural breakwater here, 1.5 kilometers long and 500 meters wide. The middle of the causeway was covered with sand washed up by the sea, crystal white, forming a sandy path. In the 21st century, the cape had stone bunkers, a watchtower, and a lighthouse built by the Qing Dynasty customs in the 19th year of the Guangxu reign (1893). Although there was nothing on the causeway in this time-space, the overall landform was very similar.
 
-　　“减速，注意观察水下。”北炜提醒到。临高角除了这部分露在水面上的堤岸外，在水下还有相当长的一部分淹没部分，虽然汽艇吃水几乎可以忽略不计，但是万一被礁石擦底也损失不小。
+"Slow down, watch the water below," Bei Wei warned. Besides the part of the causeway visible above the water, Lingao Cape had a considerable submerged portion. Although the motorboat's draft was almost negligible, scraping against a reef would still cause significant damage.
 
-　　海水清澈透明，水下礁石间细白的沙子几乎清晰可辨。小艇越过临高角进入了昌拱湾，即使不用望远镜，艇上的人们也能看到伸向东南角的博铺角了。整个昌拱湾就这样被两角环抱，宽约二公里的海湾湾底平静如席，沙明水静，只有细微的白浪在岸边翻滚。
+The seawater was clear and transparent, and the fine white sand between the underwater reefs was almost clearly visible. The small boat passed Lingao Cape and entered Chang'gong Bay. Even without binoculars, the people on the boat could see Bopu Cape extending to the southeast. The entire Chang'gong Bay was thus embraced by the two capes. The bottom of the two-kilometer-wide bay was as calm as a mat, with bright sand and clear water, only fine white waves rolling on the shore.
 
-　　“真想在这里游泳啊。”有人说。
+"I really want to swim here," someone said.
 
-　　“以后在这里盖个高干疗养院！”
+"We'll build a high-cadre sanatorium here in the future!"
 
-　　大家都笑了起来，现在说这个感觉有些荒唐，犹如一群穷人说发财了以后将如何如何。
+Everyone laughed. Saying this now felt a bit absurd, like a group of poor people talking about what they would do after they got rich.
 
-　　北炜小心的要操艇的人注意不要太深入湾内，万一要射来一箭可不是闹着玩的。
+Bei Wei carefully instructed the helmsman not to go too deep into the bay. An arrow shot from the shore would be no laughing matter.
 
-　　“队长，这是什么山？”李军指了一下远处博铺角上绿树丛中冒出的一个圆椭型的庞然大物。
+"Captain, what mountain is that?" Li Jun pointed to a round, elliptical behemoth emerging from the green trees on the distant Bopu Cape.
 
-　　“不是山，是烽火台。”
+"That's not a mountain, it's a beacon tower."
 
-　　“烽火台有这么大个？！”汽艇上的人都惊讶起来——他们印象中的烽火台都是西域丝绸之路上被风沙剥蚀的殆尽的土台。而这个台即使400年后也还有16米高。此时北炜目测它的高度至少在20米以上，45度的坡度，乍一看很象一座丘陵地带常见的小山丘。全台周身都是用片石块砌成的，内部由土夯而成。和21世纪塌毁剥落严重，长满杂树野草的荒丘完全不是一回事。
+"A beacon tower can be that big?!" The people on the motorboat were surprised. Their impression of beacon towers was of the eroded earthen platforms on the Silk Road in the western regions. But this tower, even 400 years later, was still 16 meters high. At this moment, Bei Wei estimated its height to be at least 20 meters, with a 45-degree slope. At first glance, it looked very much like a small hill common in hilly areas. The entire tower was built of stone slabs, with a rammed earth core. It was completely different from the collapsed, severely eroded, and overgrown mound of the 21st century.
 
-　　“大家注意安全，这里有明军驻扎的，拉下面罩！”
+"Everyone, be careful. There are Ming troops stationed here. Pull down your visors!"
 
-　　随着命令，全体人员都把自己的防暴头盔上的面罩拉了下来。汽艇迅速的绕过博铺角，进入东南海域。
+With the command, all personnel pulled down the visors on their riot helmets. The motorboat quickly rounded Bopu Cape and entered the southeastern sea area.
 
-　　“博铺港！”
+"Bopu Port!"
 
-　　此地就是临高县境内最大的河流——文澜江的入海口了。这条全长不到90公里的大河，在此地形成了一个开阔的港湾，湾口向北。远处的一处影影绰绰的黑色岛屿影子就是红石岛——博铺港的东缘。
+This was the estuary of the Wenlan River, the largest river in Lingao County. This river, less than 90 kilometers long, formed a wide harbor here, with its mouth facing north. The shadowy black island in the distance was Hongshi Island—the eastern edge of Bopu Port.
 
-　　“减速！进入港内，戒备！”
+"Slow down! Enter the port, on alert!"
 
-　　红石岛对面的港湾海滩是泥沙质的，长满了大片郁郁葱葱的红树林，有的地方可以看到非常突兀的被烧毁和砍伐过的痕迹，在红树林后面，是高低起伏的台地，并不高，顶端参差不齐。在这些红树林的对面，港湾的南部却是一片截然不同的环境，荒草蔓生，似乎还有房屋的废墟。
+The beach of the bay opposite Hongshi Island was sandy and muddy, covered with large, lush mangrove forests. In some places, there were very abrupt traces of burning and logging. Behind the mangroves were undulating tablelands, not high, with uneven tops. Opposite these mangroves, the southern part of the bay was a completely different environment, overgrown with wild grass, with what appeared to be the ruins of houses.
 
-　　岸滩上散乱着枯萎的海草和大量被拔起的树木，这是台风不久前光临过的证据——之所以选择在农历九月才登陆，一个重要原因就是避开每年八月十五前后都会来的台风和风暴潮灾害。
+The shore was scattered with withered seaweed and a large number of uprooted trees, evidence of a recent typhoon. One of the important reasons for choosing to land in the ninth lunar month was to avoid the typhoons and storm surges that came around the 15th of the eighth lunar month every year.
 
-　　港湾内部相当的开阔，靠近海水的地方都是大片的红树林，滩涂纵横，各式各样的水鸟在天空中起落盘旋。水质不清，明显看得出泥底。岸边平坦，稍有起伏。出乎意料，望远镜里没有任何渔船的身影——这有点不对劲嘛……
+The interior of the harbor was quite open, with large mangrove forests near the water, crisscrossed with mudflats. Various water birds circled in the sky. The water quality was not clear, and the muddy bottom was clearly visible. The shore was flat, with slight undulations. Unexpectedly, there were no fishing boats in sight through the binoculars—this was a bit strange...
 
-　　“这鬼地方真荒凉！”已经有人感慨起来了。
+"This godforsaken place is so desolate!" someone had already exclaimed.
 
-　　“这就是执委会说的已经开发成熟的县？那开发不成熟的地方不都是原始森林了？”
+"This is the 'well-developed' county the Executive Committee was talking about? Then aren't the undeveloped places all primeval forests?"
 
-　　北炜不悦地瞥了一下说话的人——退伍当群众久了连基本的军人纪律都忘记得差不多了。
+Bei Wei glanced unhappily at the speaker—after being a civilian for so long since leaving the army, he had almost forgotten basic military discipline.
 
-　　博铺这个地方虽然号称进出海南的要津，但是长久以来海盗每次寇略琼北往往视此为捷径。久而久之，除了少量捕鱼的疍民为了捕鱼而散居此地外，一直到康熙年间还是荒凉不堪。当时的临高县令樊庶到此地视察，感叹之余还赋诗一首来描写此地的环境：
+Although Bopu was known as a key point of entry and exit for Hainan, it had long been seen as a shortcut for pirates raiding northern Qiongzhou. Over time, apart from a small number of Dan boat-people who lived scattered here for fishing, it remained desolate until the Kangxi era. The then-magistrate of Lingao County, Fan Shu, inspected this place and, moved by what he saw, wrote a poem to describe the environment:
 
-　　匹马频行历海滨，
+*A lone horse oft travels the coast,
+Where in deep wild smoke, an old pass is lost.
+White waves fill the eye, Danzhou and Chengmai's border,
+Yellow hats shade the heads of the Dan stove-folk in order.
+Three-foot low eaves guard against the typhoon's mother,
+A fist-sized small stone worships the Dragon God, no other.*
 
-　　荒烟深处旧关津。
+...
 
-　　白波满目儋澄界，
+"Cut the engine! Measure the water depth."
 
-　　黄笠遮头疍灶人。
+They had complete hydrographic data for Bopu Harbor. According to the data, the depth of the estuary harbor ranged from 2 to 10 meters. However, this was the 17th century, and 400 years of siltation and river course changes could lead to large errors.
 
-　　三尺矮檐防飓母，
+The motorboat began to move slowly. Li Jun held up a steel riot shield, protecting the hydrographic staff as they lowered a lead line.
 
-　　一拳小石祀龙神。
+Bei Wei knew that the motorboat had now become a perfect target, completely exposed on the open water. He wasn't afraid of someone shooting an arrow—the crude iron arrowheads couldn't penetrate their anti-stab vests and helmets. But if the enemy had a small cannon hidden in the grass on the shore, a volley of iron sand and lead shot from 50 meters away would definitely cause casualties.
 
-　　……
+The members of the military group held their guns, bullets chambered, monitoring every corner of the surroundings.
 
-　　“关舵机！测量水深。”
+At this very moment, on the beacon tower, a figure was also observing the small boat in the bay.
 
-　　他们手里有完备的博铺港湾水文资料，根据水文资料，河口港湾的水深从2米到10米不等，不过现在是17世纪，400年的泥沙淤积河道变化会有很大的误差。
+This person wore a bowl-shaped iron helmet covered with a thick layer of yellow rust, and a suit of rotting leather armor—it was from the tenth year of the Jiajing reign, when the court had increased the weaponry of the various guards in Hainan. In his hand, he held a waist saber of the same age, its wooden scabbard so rotten it had fallen apart, barely held together with rattan strips.
 
-　　汽艇开始缓慢的划行，李军竖起了一面武警钢制防暴盾牌，掩护着水文工作人员放铅绳。
+Behind him was a soldier, also with a rusty iron helmet on his head, but no armor, wearing a tattered and indistinguishable mandarin duck battle robe. He carried a bow and arrows on his back and also had an ancient waist saber at his hip.
 
-　　北炜清楚，此时的汽艇变成了一个很好的靶子，在开阔的水面上一无遮拦。他倒不怕谁来射一箭，反正那种粗糙的铁箭头是射不穿防刺服和头盔的，但是要是对方有一门小炮藏在岸边的草丛里，50米外打来一顿铁砂铅子是肯定会出现伤亡。
+Fu Baiwen was from Qiongshan County. He had practiced martial arts in his youth and had obtained the rank of a military scholar, but had never been able to advance further. Nearing forty, he had managed to get the post of a subordinate ninth-rank Patrol Inspector, leading twelve archers to guard this "Key Pass of the Qiong Sea." Although this place was called a pass, there were few travelers. On a normal day, all he could interrogate were some Dan fishermen and small merchants who came over from Leizhou to trade by sea. There was no profit to be made, and it was desolate and lonely. The most common sight was pirates.
 
-　　军事组的人都持枪在手，子弹上膛，监视着周边的每个角落。
+Because Hainan was located on an important maritime route, it had always been a place where pirates were rampant. Historically, pirates had repeatedly plundered Lingao, even besieging the county town. In the eleventh year of the Shunzhi reign, they had even captured the magistrate of Lingao. The Ming and Qing governments had no effective countermeasures, doing little more than building numerous beacon towers and lighting a warning fire at the first sign of unusual activity at sea.
 
-　　正在此时，烽火台上，一个身影也在那里观察着海湾里的小艇。
+When pirates anchored here to take on water, everyone left each other in peace. But once they entered the bay and launched boats to land, the only thing Inspector Fu could do was to immediately run to the beacon tower to light the pile of horse manure fire, and then take his men to find a place to hide. Once the beacon was lit, the smoke and fire could be seen for dozens of li along both banks of the Wenlan River up to Lingao County town. The common people would flee, and the city gates would be immediately closed.
 
-　　此人头戴一顶生了一层厚厚黄锈的碗口铁盔，身穿霉烂不堪的皮甲——还是嘉靖十年朝廷增加海南各卫兵器时添置的。手里提着一柄同样年龄的腰刀，木鞘都烂得散了架，用藤条勉强缠着。
+Every year after the 15th of the eighth lunar month, as the typhoons gradually subsided, the coastal raids by pirates would become more frequent. The fishing boats that usually took shelter here had not come recently. Naturally, he and his patrol archers could not be negligent—although their pay was meager, it was still a living.
 
-　　他身后是一个兵，脑袋上同样有锈迹斑斑的铁盔一顶，无甲，穿着一件破破烂烂里外不辨的鸳鸯战袄。背着一副弓箭，腰里也有一柄年高德勋的腰刀。
+The moment the reconnaissance team's motorboat entered Chang'gong Bay, the archer on watch at the beacon tower saw it. Normally, he wouldn't have disturbed the Inspector for such a small boat, but he was astonished by how fast it was moving. By the time the boat entered the estuary, the men on board were all tall and sturdy, wearing iron helmets and black armor, and carrying black iron fire-tubes. This was an alarming situation, and he quickly summoned Inspector Fu to the beacon tower.
 
-　　符柏文是琼山县人，少时习武，得过一个武秀才的科名，一直没再能登科。年近四十混了一个从九品的巡检之职，带着十二名弓兵看守这个“琼海要津”。此地虽然号称关津，实则旅客来往不多，平日能盘查的也就是些疍家渔民和从雷州那边过来贩海的小商人而已，即无油水，又荒凉寂寞，见得最多的，还是海盗。
+"Inspector Fu, who are these people?" the archer asked softly from behind. "Should we go up and question them?"
 
-　　海南因为地处重要的海上交通要道，一直是海盗极度猖獗的地方，历史上海盗曾经多次寇掠临高，甚至围攻县城，顺治十一年居然把临高知县都给俘虏了。明清两代政府对此也没什么对策，无非就是广筑烽火台，一见海上异动就举火报警。
+"I've never seen them before." Although Hainan was a southern frontier prefecture, its people were quite worldly. Fu Baiwen had seen Japanese, Portuguese, and even Red-Haired Barbarians, but the boat and the men before him were outside his scope of knowledge. The only thing he could tell was that this group was clearly not to be trifled with.
 
-　　海盗在这里泊船取水的，大家相安无事。一但深入港湾放艇登陆。符巡检唯一可做的事情就是马上跑到烽火台上去点那堆马粪火，然后带着人找个地躲起来。一点烽火，沿文澜江两岸直临高县城方圆几十里都能看到烟火，百姓躲避，城门也随即关闭。
+"It looks like they are measuring the water depth?"
 
-　　每年到了农历八月十五过后，台风渐熄，海盗的沿岸抄掠也就频繁起来。平时在此地避风休憩的渔船，最近也都不来了，他们这些巡检的弓兵，自然也不能怠慢——粮饷虽少，好歹也是一份钱粮。
+Fu Baiwen nodded. As the small boat moved, behind that black shield, someone was constantly lowering and raising a rope. Measuring the water depth meant that a large ship was coming.
 
-　　侦察队的汽艇一进到昌拱湾，烽火台上瞭望的弓兵就看到了。一般这样的小船他是不会去惊动巡检老爷的，但是这小船行驶的如此之快，让他很吃惊，等船进到河口，来人个个身材魁梧，头戴铁盔身穿黑甲，手里还拿着黑乎乎的铁火铳，这状况可不得了，赶紧把符巡检给请上了烽火台。
+"Should we light the fire?"
 
-　　“符巡检，这些是什么人，”弓兵在后面轻声问，“要上去盘查么？”
+He hesitated for a moment, then immediately made up his mind. The newcomers were few, but they were fully armored, which was already against the law. They were definitely not good people. And they were secretly measuring the water depth here, which clearly meant a larger force was coming. It was about to be broad daylight, and the common people would be going out to work. If these were bandits come to plunder, the people would suffer greatly!
 
-　　“没见过。”海南虽然是南陲州县，但是老百姓的见识却不少。符柏文见识过倭人、佛郎机人，也见过红毛夷人，眼下这船这人都不在他的常识范围之内。唯一能看出来的就是这伙人显然不好惹。
-
-　　“好像在测水深啊？”
-
-　　符柏文点点头：随着小艇的划动，那个黑乎乎的盾牌后面，有人在不断的收放绳子。测水深意味着有大船要进来。
-
-　　“点火么？”
-
-　　他迟疑了一下马上下了决心：来者人少，但是全身甲胄，已经是犯禁之人，绝非良民，又在这里私测水深，显见还有大股人马要来。现在天光即将大亮，百姓们都要出门营生，若是匪人掳掠，就要大受荼毒了！
-
-　　“点火！”
+"Light the fire!"
