--- a/_posts/2009-10-2-1-03200.md
+++ b/_posts/2009-10-2-1-03200.md
@@ -1,120 +1,120 @@
 ---
 layout: post
-title: 第三十二节 应对
+title: "Section 32: The Interrogation"
 category: 1
 path: 2009-10-2-1-03200.md
 tag: [normal]
 ---
 
-　　睡眠是最接近死亡的状态，[文总][y002]从梦中苏醒的时候，脑海中不知怎么的跳出了这么一句话。睁开双眼，一帐浅红罗水草纹的帐顶飘飘摇摇，鼻畔传来淡淡的幽香，受用的闭起了眼睛——忽然又睁开了，这哪啊！
+*Sleep is the state closest to death.* The phrase inexplicably popped into [Director Wen][y002]'s mind as he awoke from his dream. He opened his eyes to a swaying canopy of light red gauze with a water-grass pattern. A faint, pleasant fragrance wafted to his nose. He closed his eyes to savor it, then snapped them open again. Where was he?!
 
-　　要不是[文总][y002]已经经历了虫洞，眼下他十有八九会以为自己是魂穿了。脑子稍稍清醒了一些：自己不是住在高举送的宅子里的么？那床铺虽有帐子，不过是普通的青布帐幔。哪有这么脂粉气，这到底是哪？
+If [Director Wen][y002] hadn't already experienced traveling through a wormhole, he would have sworn he had been transmigrated again. As his mind cleared a little, he remembered: wasn't he staying in the residence provided by Gao Ju? The bed there had a canopy, but it was made of plain blue cloth. It wasn't this... perfumed. Where on earth was this place?
 
-　　赶紧坐起身子，却觉得头昏沉沉的，四肢酸软，一点力气也没有。环视四周，是个极小的房间，四下无窗。除了身下的大床，不过一几一椅，几上陈设着花瓶盆景之类，壁上悬着二幅山水画。
+He quickly sat up but felt dizzy and heavy-headed. His limbs were sore and weak, completely devoid of strength. He looked around and found himself in a tiny, windowless room. Besides the large bed he was on, there was only a small table and a chair. The table held a vase and a bonsai, and two landscape paintings hung on the wall.
 
-　　赶紧起来穿好衣物，发觉防刺背心、皮带和防水靴没了，从不离身的大折刀、电击器、防狼喷剂全都不翼而飞。这把他吓得不轻。作为一个身体力行多年的“生存狂人”，这几样东西差不多就是[文德嗣][y002]的护身法宝，现在身在不测，防身宝贝皆无……
+He hurriedly got up and dressed, only to find that his anti-stab vest, belt, and waterproof boots were gone. His ever-present large folding knife, stun gun, and pepper spray had all vanished. This discovery terrified him. As a long-time, hands-on "survivalist," these items were [Wen Desi][y002]'s talismans. Now, in this precarious situation, all his means of self-defense were gone...
 
-　　正惊惶间，门响了一声，进来个中等身材的精瘦汉子，面色里透出一股戾气。[文总][y002]何等人物，一眼就知道来者不是善类，眼下自己处境不清，干脆默然不语。
+Just as panic set in, the door creaked open. A lean, medium-statured man with a fierce look on his face entered. [Director Wen][y002], a man of the world, could tell at a glance that this was no friendly face. With his situation unclear, he decided to remain silent.
 
-　　“文掌柜好啊。”来人大大咧咧的拱了拱手，有意无意地露出腰胁下的胁差的刀把。[文德嗣][y002]听出他的口音略带闽南腔。
+"Greetings, Shopkeeper Wen," the man said with a casual bow, intentionally or not revealing the hilt of a wakizashi tucked into his belt. [Wen Desi][y002] noted his accent had a slight Southern Fujianese lilt.
 
-　　“不知尊驾何人？”
+"And who might you be?"
 
-　　汉子嘿嘿笑了笑，大大咧咧的在椅中坐下：“我等都在海上讨生活。最近闻听文掌柜从澳洲来，贩卖奇货发了大财。不道船泊哪里，针路（即航路）几何？兄弟们也好在海上有个照应。”
+The man chuckled and sat down brazenly in the chair. "We all make our living on the sea. We've recently heard that you, Shopkeeper Wen, have come from Australia and made a fortune selling exotic goods. We were wondering where your ship is docked and what your shipping routes are. It would be good for us brothers to look out for each other on the seas."
 
-　　[文德嗣][y002]却不答话，只问：“这里是什么地方？”
+[Wen Desi][y002] didn't answer, instead asking, "What is this place?"
 
-　　汉子哈哈一笑：“此地不过是文掌柜暂居之处，何必知晓。我等对澳洲之事十分好奇，望掌柜的不吝赐教。”说罢露出恐吓神气来。
+The man laughed loudly. "This is merely a temporary residence for you, Shopkeeper Wen. Why do you need to know? We are very curious about Australia and hope you will enlighten us," he said, his tone turning threatening.
 
-　　[文总][y002]心想就你这么个瘦小干瘪的货色，难道老子还怕你不成？称心早就一顿拳脚过去，奈何此刻手脚酸软无力，连动一下都难。好汉不吃眼前亏，只好应道：
+*You skinny, dried-up runt, you think I'm afraid of you?* [Director Wen][y002] thought. Under normal circumstances, he would have already let his fists do the talking, but his limbs were currently weak and sore; it was difficult to even move. A wise man doesn't fight when the odds are against him. He had no choice but to comply.
 
-　　“好说，不知道尊驾想听什么？”
+"Of course. What would you like to know?"
 
-　　“尔等来大明所乘是何船，船现泊在何处？”
+"What kind of ship did you take to the Great Ming, and where is it currently docked?"
 
-　　[文德嗣][y002]最怕别人问及此事，因为根本无从解释。谎言也很难造——稍一调查就知道。既然从不存在什么澳洲船，那唯一的办法就是推在存在的船只身上。
+This was the question [Wen Desi][y002] dreaded most, as it was impossible to explain. A lie would be hard to fabricate and easily exposed with a little investigation. Since there was no Australian ship, the only option was to pin it on an existing one.
 
-　　“澳洲所造船只不利远航，所以只到勃泥。从勃泥再换搭佛朗机船来。”这话说得真伪难辨，王头儿也不便驳他，又问他如何进得广州城。
+"The ships made in Australia are not suitable for long voyages, so we only sail to Borneo. From Borneo, we transfer to a Portuguese ship to come here." The statement was a mix of truth and falsehood, making it difficult for the man, Boss Wang, to refute. He then asked how they had entered Guangzhou city.
 
-　　[文德嗣][y002]心中瞬间转过许多念头，这伙人既然把自己绑架出来，显然和高举不是一路的，搞不好还是对头。现在只能把所有可查证的事情都和高举连在一起，他们就无法去对证，谎话便不会被戳穿。当下把以往[萧子山][y001]和他说过的关于濠畔街走私商人的种种事情都过了一遍。已然成竹在胸，说：
+Numerous thoughts raced through [Wen Desi][y002]'s mind. Since this group had kidnapped him, they were clearly not on the same side as Gao Ju; they might even be his rivals. His only option was to link all verifiable facts to Gao Ju, making it impossible for them to cross-check and expose his lies. He quickly reviewed everything [Xiao Zishan][y001] had told him about the smugglers on Haopan Street. With a plan in mind, he said:
 
-　　“我等在澳洲就听海外番商言大明广州城富庶敌国，只是外人不得入城交易。也是机缘巧合，从一佛郎机水手那里知道珠江口外有个游鱼洲，是番商做私货贩运的好去处，便在那里下得船，花钱托人送我们进的广州城，那人便把我们送到高举府上。”
+"While in Australia, we heard from foreign merchants that the city of Guangzhou in the Great Ming is as wealthy as a nation, but outsiders are not allowed to trade within its walls. By a stroke of luck, we learned from a Portuguese sailor about a place called Youyu Island, just off the mouth of the Pearl River, a good spot for smugglers. We disembarked there and paid someone to bring us into Guangzhou. That person brought us to Gao Ju's residence."
 
-　　“哦，哪人姓甚名谁？”
+"Oh? And what was this person's name?"
 
-　　“初来乍到，不敢多问。似乎是姓汪。”
+"We were new here and didn't dare to ask too many questions. I believe his surname was Wang."
 
-　　游鱼洲上的汪老大，这也是偶然才从高家仆人那里刮到的一句耳风而已。
+Boss Wang of Youyu Island—a name he had only managed to overhear from one of Gao's servants.
 
-　　“咦，汪老大怎么说不知道你们这些澳洲海商呀？”门外，忽然传来了一个清脆娇媚女声。
+"Oh? But Boss Wang says he doesn't know any Australian sea merchants," a clear, charming female voice suddenly came from outside the door.
 
-　　语音一落，门后便转过一个妙龄少女来，一件藕合色对襟紧身小袄，下着雪青色的细褶长裙。身材高挑，眉弯唇红，肤色莹白如玉。眼睛又大又亮，说话间眼波流转，自有一种媚态。再定睛看，眉眼间却带着隐约的煞气。
+As the voice faded, a beautiful young woman appeared from behind the door. She wore a tight-fitting, lotus-root-colored jacket and a snow-blue, finely pleated long skirt. She was tall, with arched eyebrows, red lips, and skin as white as jade. Her eyes were large and bright, and as she spoke, they seemed to dance with a natural charm. But upon closer inspection, there was a hidden fierceness in her gaze.
 
-　　王头儿却象很顾忌这少女一般，忙赔笑着站起来让座。少女也不客气，款款落座，一双妙眼，仿佛能直透人心一般，在[文总][y002]身上乱转。看得[文德嗣][y002]心中乱扑腾，想这妞什么路数？17世纪的大明哪来这号人物？
+Boss Wang seemed to be wary of this young woman, quickly standing up with an apologetic smile to offer her his seat. The girl accepted without ceremony, sitting down gracefully. Her enchanting eyes, which seemed to see right through a person, roamed all over [Director Wen][y002]. His heart pounded. *What's this girl's deal?* he wondered. *How can a character like this exist in the 17th-century Ming Dynasty?*
 
-　　“这位是？”[文德嗣][y002]被她那句话搅得心神不宁，知道此时开口辩白易出破绽，先来个缓兵之计。
+"And this is?" [Wen Desi][y002] was unsettled by her words, knowing that any attempt to argue now would likely expose his lies. He decided to play for time.
 
-　　“呔，与你不相干……”
+"Hey, it's none of your business..."
 
-　　“哎，王头儿你可别这么说，我又不是什么歹人，也是海上竖得起字号的人物。遮遮掩掩做什么？我是李丝雅——”她说着站起身子，双手提起裙摆，右脚后退一弯，竟行了个曲膝礼。[文总][y002]的脑子当场嗡了一声，难道这妞也是穿越者？这世界上除了他们，还有其他穿越者？！
+"Now, now, Boss Wang, don't say that. I'm not some villain. I have a reputable name on the seas. Why be so secretive? I am Li Siya—" She stood up, lifted the hem of her skirt, and stepped back with her right foot, performing a curtsy. [Director Wen][y002]'s mind buzzed. *Could this girl be a transmigrator too? Are there others besides us?!*
 
-　　勉强定住心神，站起来微鞠一躬：“我是[文德嗣][y002]。”
+He forced himself to calm down, stood up, and gave a slight bow. "I am [Wen Desi][y002]."
 
-　　这回轮到李丝雅小小得吃惊了：“澳洲也是行得西礼？”
+This time, it was Li Siya's turn to be slightly surprised. "You also follow Western etiquette in Australia?"
 
-　　[文德嗣][y002]见女孩子发色瞳仁略带棕色，一头长发微微带鬈。知道这女孩子多半有葡萄牙人的血统，这样的土生二代在澳门很常见，父母是葡萄牙人的都有。曲膝礼不过是西式礼仪而已，这才定了心，微笑道：
+[Wen Desi][y002] noticed the girl's hair and pupils were a light brown, and her long hair was slightly curly. He realized she likely had Portuguese ancestry. Such second-generation mixed-race individuals were common in Macau, some with fully Portuguese parents. The curtsy was just a form of Western etiquette. His mind settled, and he smiled.
 
-　　“澳洲日常都是行西礼的。”
+"In Australia, it is common to follow Western etiquette."
 
-　　“那你们还自称华夏子民？这不是礼崩乐坏吗？”少女调笑道。
+"And you still call yourselves children of Huaxia? Isn't that a collapse of rites and music?" the girl teased.
 
-　　“我等心向华夏，便是华夏子民，与礼乐无关。”
+"Our hearts belong to Huaxia, so we are children of Huaxia. It has nothing to do with rites and music."
 
-　　“气势还蛮壮的。”李丝雅坐在椅子上，随手玩弄着一把小刀——[文德嗣][y002]认出这便是他常年随身的大折刀——“不过文掌柜你还没回答我的话呢，汪老大可不认得你呀？”她百无聊赖地望着[文总][y002]，娇声说：“下半生，还打算以男人的形态存在吧？”
+"Quite the spirit," Li Siya said, sitting down and casually playing with a small knife—which [Wen Desi][y002] recognized as his own large folding knife. "But Shopkeeper Wen, you haven't answered my question. Boss Wang doesn't know you, you see?" She looked at him with a bored expression and said in a sweet voice, "You do plan on existing in the form of a man for the rest of your life, don't you?"
 
-　　[文德嗣][y002]冷汗直冒，知道这少女虽然言语娇俏，下手多半狠辣无比。对待这样的人，下软蛋是不行的，硬顶也不行。心想我只是说大约姓汪，又没说是哪个汪。再者他听[萧子山][y001]说过，象游鱼洲上的渔民走私团伙这样的团体排外性很强，外人不可能打听得到消息。他心里冷笑一声：你不过是放一记“金钟罩”罢了。
+Cold sweat beaded on [Wen Desi][y002]'s forehead. He knew that despite her charming words, this girl was likely ruthless. Cowering wouldn't work against someone like her, but neither would direct confrontation. He thought, *I only said his surname was* probably *Wang, I didn't specify which one.* Besides, he had heard from [Xiao Zishan][y001] that smuggling groups like the fishermen on Youyu Island were extremely exclusive, and it was impossible for outsiders to get information. He sneered inwardly: *You're just trying to bluff me.*
 
-　　“我可不认得什么汪老大，只不过好像听说此人姓汪而已。”为了缓和下语气，他笑了笑，“我等从海外来，只知道卖货赚钱，不兴打听他人长短的。”
+"I don't know any Boss Wang. I only heard that the person's surname seemed to be Wang." To soften his tone, he added with a smile, "We come from overseas, only interested in selling goods and making money. We don't make it our business to pry into others' affairs."
 
-　　“你们还真是黑眼睛里只有白银子。”
+"You people really only have silver in your black eyes."
 
-　　“见笑见笑，商人逐利乃是本性。”
+"You flatter me. It is the nature of a merchant to pursue profit."
 
-　　“我怎么觉得文掌柜和您的那些手下，个个都是不凡的人物呢？”李丝雅的身子微微的靠了过来，一股淡淡的蔷薇水的味道传到他的鼻端，“逐利？世人哪个不是蝇蝇逐利之徒，就是那当皇帝的，也不过是逐他一家一姓的利罢了。”她眼波一转，“文掌柜，我说得可对？”
+"But why do I feel that you, Shopkeeper Wen, and all your subordinates are extraordinary individuals?" Li Siya leaned slightly closer, and the faint scent of rosewater reached his nose. "Pursuing profit? Who in this world isn't a fly chasing after profit? Even the emperor is merely pursuing the interests of his own family and name." Her eyes shifted. "Shopkeeper Wen, am I right?"
 
-　　“是，是。李小姐见教的是。”[文德嗣][y002]又开始怀疑她是不是穿越者了，如果她真得是的话，最好不是腐女……正胡思乱想间，见那李MM正襟危坐，在几上排出一堆东西，乱七八糟什么都有，连[萧子山][y001]的袜子、[王工][y003]的签字笔都有。共同特点是都不是这个时空的产物。
+"Yes, yes. Miss Li's teachings are wise." [Wen Desi][y002] began to suspect again that she might be a transmigrator. *If she is, I hope she's not a fujoshi...* As his mind wandered, he saw Miss Li sit up straight and arrange a pile of items on the table. It was a random assortment, including even [Xiao Zishan][y001]'s socks and [Engineer Wang][y003]'s pen. The common feature was that none of them belonged to this era.
 
-　　“这些都是澳洲所产吗？”
+"Are all these produced in Australia?"
 
-　　“是澳洲所产。”
+"Yes, they are."
 
-　　接着这位仪态万方的小美女，居然拎起了[萧子山][y001]的锦纶丝袜子——显然她知道这东西是什么，用的是一根竹签。
+Then, this graceful beauty picked up [Xiao Zishan][y001]'s nylon socks—clearly, she knew what they were—using a bamboo stick.
 
-　　“这袜子，是怎么做出来的？这丝又是怎么剿得？为什么这般透明，又能松紧自如？”
+"These socks, how are they made? And this thread, how is it spun? Why is it so transparent, yet so elastic?"
 
-　　“这是针织袜子，用针织机做出来的。”[文德嗣][y002]对近代机械十分熟悉：第一台手摇针织机型是1598年在英国发明，一次只能钩16个线圈，还相当原始。到此时不过30年，估计葡萄牙人也未必知道。
+"These are knitted socks, made with a knitting machine." [Wen Desi][y002] was very familiar with modern machinery. The first hand-cranked knitting machine was invented in England in 1598, capable of only 16 stitches at a time, still quite primitive. Only 30 years had passed since then; he estimated the Portuguese probably didn't know about it yet.
 
-　　“用的是机器？”少女若有所思地看着[萧子山][y001]的袜子。
+"It uses a machine?" the girl mused, looking at [Xiao Zishan][y001]'s socks.
 
-　　“是的。”
+"Yes."
 
-　　“那这丝呢？生丝是做不出这样的弹性的。”
+"And the thread? Raw silk can't produce this kind of elasticity."
 
-　　[文德嗣][y002]想这事情不大好解释，针织机这东西还能说个子丑寅卯的。告诉她这丝是石油里炼出来的？那自己下半身恐怕马上就不会以男人的形态存在了。
+[Wen Desi][y002] thought this would be difficult to explain. He could talk about the knitting machine, but telling her the thread was refined from petroleum? The lower half of his body would probably cease to exist in its male form immediately.
 
-　　“此物名叫锦纶丝，不是蚕丝。如何产出在我国乃是一个秘密，我等商人哪里知道。”
+"This material is called nylon thread, not silk. Its production is a national secret in our country. How would a mere merchant like me know?"
 
-　　李丝雅点了点头，目光中却露出失望的神色来。[文德嗣][y002]心中一动，这MM纤长的大腿上没有一双长袜岂不是暴戾天物。看来下次应该大量贩运尼龙丝袜……
+Li Siya nodded, a look of disappointment in her eyes. A thought stirred in [Wen Desi][y002]'s mind: it would be a crime against nature for this girl's slender legs not to be adorned with a pair of stockings. It seemed they should start importing nylon stockings in large quantities...
 
-　　“澳洲的书写之法看来也是西式的。这枝笔不用蘸墨，端得十分方便。”李丝雅慨叹一声，摆弄着签字笔，有些爱不释手，“你们的货物真让我有坐井观天之感。想不到世间还有这样的地方，能做出如此奇巧精妙的东西。”
+"It seems the Australian way of writing is also Western-style. This pen doesn't need to be dipped in ink, which is very convenient." Li Siya sighed, fiddling with the pen, unable to put it down. "Your goods truly make me feel like a frog in a well. I never imagined there was such a place in the world that could produce such wonderfully ingenious things."
 
-　　“见笑了。”
+"You're too kind."
 
-　　“这次你们趟开海路，往后自然是要常年贩运了？”
+"Now that you've opened up this sea route, you will naturally be trading here year-round?"
 
-　　“这个……”[文德嗣][y002]不知道如何回答是好。
+"Well..." [Wen Desi][y002] didn't know how to answer.
 
-　　“哼，也无所谓。”少女冷冷一笑，似是自言自语，“粤广一带的洋面，落在大当家的之手也是朝夕之事了。若要长久保得船货平安，还是识时务为好！”说罢，自顾自的起身去了。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
+"Hmph, it doesn't matter," the girl said with a cold smile, as if talking to herself. "The seas around Guangdong will fall into the hands of the Big Boss sooner or later. If you want to ensure the long-term safety of your ships and cargo, it would be wise to be pragmatic!" With that, she stood up and left on her own.
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
