--- a/_posts/2009-10-20-2-00300.md
+++ b/_posts/2009-10-20-2-00300.md
@@ -1,95 +1,96 @@
 ---
 layout: post
-title: 第三节 新开始
+title: "Section 3: A New Beginning"
 category: 2
 path: 2009-10-20-2-00300.md
 tag: [normal]
 ---
 
-　　“队长，烽火台上有火光！”负责观察的梅晚报告。
+"Captain, there's firelight on the beacon tower!" reported Mei Wan, who was on observation duty.
 
-　　北炜抬头一看，烽火台上已经燃起了一堆篝火，在微明的天空下一股浓烟直冲云霄。
+Bei Wei looked up. A bonfire was already burning on the beacon tower, a column of thick smoke rising straight into the sky in the dim light of dawn.
 
-　　虽然这个情况已在预计之中，他还是有些沮丧——如果能无声无息的拔掉这个警戒哨就好了。但他的方案被席亚洲枪毙了——特种作战的准备工作太花时间。穿越者们要尽快展开登陆行动，在消息没有扩散开之前就在岸上站稳脚跟。琼州海峡这里古代就是海上交通要道和渔场，天一大亮，这么一支超越时代的船队是瞒不了任何人的，拔掉烽火台和不拔掉，差不了一二个小时。
+Although this situation was expected, he was still somewhat frustrated—it would have been better if they could have silently eliminated this warning post. But his plan had been shot down by Xi Yazhou—the preparations for a special operation would take too much time. The transmigrators needed to launch their landing operation as quickly as possible and establish a firm foothold on shore before the news could spread. The Qiongzhou Strait was a major maritime route and fishing ground in ancient times. Once the sun was fully up, such an anachronistic fleet could not be hidden from anyone. Eliminating the beacon tower versus not eliminating it would only make a difference of an hour or two.
 
-　　“不去管他，继续测水。”北炜命令道，眼下尽快让船进港才是真得。
+"Ignore it, continue measuring the water depth," Bei Wei commanded. The real priority now was to get the ships into the harbor as soon as possible.
 
-　　可是艇上的人还是有些紧张，梅晚一边纪录着水深线，一边悄声问北炜：
+However, the people on the boat were still a little nervous. As Mei Wan recorded the depth readings, he whispered to Bei Wei:
 
-　　“明军会来增援吗？”烽火一起，各路援兵纷纷而来——这是他们在电影和小说里常见的情节。
+"Will the Ming army send reinforcements?" When the beacon is lit, reinforcements from all directions come rushing in—this was a common plot point they had seen in movies and novels.
 
-　　“不会。”其实北炜自己也心中无底。于鄂水信誓旦旦的说，临高城里是没有驻军的，烽火台起得是预警的作用。虽然他不怕小股的明军或者任何当地武装，不过无谓的流血还是越少越好。
+"They won't." In truth, Bei Wei wasn't entirely sure himself. Yu E'shui had sworn that there was no garrison in Lingao county town, and that the beacon tower only served as an early warning system. Although he wasn't afraid of a small contingent of Ming troops or any local armed force, it was always better to have as little unnecessary bloodshed as possible.
 
-　　小艇一路划行一路测试水深投放航标，为船只进入标定航道。海水正在涨潮，波涛倒灌入河，船几乎不需要划动就被潮水带到了烽火台前的码头，台下是一片低矮的瓦房，门前立有旗杆——这里大概就是情报中说的博铺巡检司了。
+The small boat proceeded, measuring the water depth and dropping navigation buoys along the way to mark the channel for the ships to enter. The tide was rising, and the waves were flowing back into the river. The boat hardly needed to be rowed; it was carried by the tide to the pier in front of the beacon tower. Below the tower was a cluster of low-tiled houses with a flagpole in front—this was probably the Bopu Inspection Office mentioned in the intelligence reports.
 
-　　巡检司门前空无一人，高高的旗杆上还挂着未熄灭的巡检司字样的灯笼。
+The area in front of the inspection office was deserted. A lantern with the characters for "Inspection Office" was still hanging from the tall flagpole, its light not yet extinguished.
 
-　　北炜一挥手：“全体上刺刀！侦察队，目标正前方房屋，一组二组三组跟我前进！”随着口令声，北炜关上保险，第一个跃出小艇，跳上码头。
+Bei Wei waved his hand. "All hands, fix bayonets! Reconnaissance team, target is the buildings directly ahead. Groups one, two, and three, advance with me!" With the command, Bei Wei switched off his safety and was the first to leap from the boat onto the pier.
 
-　　尽管这次突击所有人都做得很标准，穿越者们占领的第一个大明官衙里却空无一人。左右厢房的床铺上，草席余温还在，伙房里已经座上了一锅水，火都没熄。这里人去楼空还没几分钟。
+Although the assault was executed perfectly by everyone, the first Ming Dynasty government office occupied by the transmigrators was completely empty. On the beds in the side rooms, the straw mats were still warm. In the kitchen, a pot of water was already on the stove, the fire not yet out. The occupants had left only a few minutes ago.
 
-　　巡检司担任的是盘查和预警，当然没必要和穷凶极恶的海盗拼命。他们地形熟悉一走了之就是。反正海盗是呆不久的，走了再回来收拾就是——巡检司里除了桌椅板凳就是些伙房的家伙，折损不了几个钱。海盗也知道这衙门里什么值钱的东西也没有，干脆过门不入。
+The inspection office's duty was interrogation and early warning; there was certainly no need for them to fight to the death with ferocious pirates. They were familiar with the terrain and could just leave. Anyway, the pirates wouldn't stay long. They could just come back and clean up after they left—the inspection office had nothing but tables, chairs, and some kitchen utensils, nothing worth much money. The pirates also knew there was nothing valuable in this government office and would simply pass it by.
 
-　　这伙21世纪的穿越者们不但到处搜寻，对所有东西都要兴致勃勃的翻看一遍——在他们的意识里这些都是古董，还要鹊占鸠巢——房子，背靠着海岸的制高点烽火台，还有码头，简直是现成的登陆指挥部么。
+But this group of 21st-century transmigrators not only searched everywhere but also enthusiastically examined everything—in their minds, these were all antiques. They also planned to take over the place—the building, backed by the commanding height of the beacon tower on the coast, and the pier, was a ready-made landing command post.
 
-　　北炜吩咐一个小组上烽火台去搜索灭火然后担任警戒，一个小组则在巡检司登顶，负责压制周边。自己通过步话机向旗舰报告登陆成功，占领博铺巡检司，行动中无人伤亡。
+Bei Wei ordered one group to go up the beacon tower to search, extinguish the fire, and then stand guard. Another group took up positions on the roof of the inspection office to cover the surrounding area. He himself reported to the flagship via walkie-talkie that the landing was successful, the Bopu Inspection Office had been occupied, and there were no casualties during the operation.
 
-　　汇报完毕，他叫来两名队员：“你们回小艇上去，沿着航路投发烟航标。引导后续船只入港。”
+After the report, he called over two team members. "You two go back to the boat and lay smoke buoys along the channel to guide the follow-up ships into the port."
 
-　　丰城轮的船楼里，听到消息后一直紧张地注视着烟柱的人们都松了口气。博铺港——临高的大门已经向穿越众打开。
+In the superstructure of the *Fengcheng*, the people who had been nervously watching the column of smoke breathed a sigh of relief. Bopu Port—the gateway to Lingao—was now open to the transmigrators.
 
-　　[马千瞩][y005]按捺住激动的心情，故作镇定的对邬德说：“开始吧！”
+[Ma Qianzhu][y005] suppressed his excitement and, feigning composure, said to Wu De, "Let's begin!"
 
-　　这个命令随即传到了所有的船只上。每艘船上都重复着同一个命令：“起锚！”
+This order was immediately relayed to all the ships. The same command was repeated on every vessel: "Weigh anchor!"
 
-　　二艘渔船前卫，二艘殿后，丰城轮和自航驳船并肩行驶，北美分舵的帆船张开雪白的船帆。船队翻滚着白浪航迹，浩浩荡荡的驶向港湾。他们身后，是一轮喷薄而出的红日，将天空染红，南中国海的海面金光闪闪，新世界的曙光第一次照耀在穿越者们的身上。甲板上的穿越众们不由自主地站起身来，心中的激动无可比拟：
+With two fishing boats in the vanguard and two in the rear, the *Fengcheng* and the self-propelled barge sailed side by side, while the North American branch's sailboat unfurled its snow-white sails. The fleet, leaving a trail of white wake, sailed majestically towards the harbor. Behind them, a red sun was bursting forth, dyeing the sky red. The surface of the South China Sea glittered with golden light. The dawn of a new world shone upon the transmigrators for the first time. The transmigrators on deck involuntarily stood up, their hearts filled with an incomparable excitement:
 
-　　我正在见证历史，我也在创造历史！
+*I am witnessing history, and I am also creating history!* 
 
-　　这样的感觉让他们如痴如醉，有人唱起了《歌唱祖国》：
+This feeling intoxicated them. Someone started singing "Ode to the Motherland":
 
-　　五星红旗迎风飘扬，胜利歌声多么响亮，
+*The five-starred red flag flutters in the wind,
+How loud the songs of victory sound,
+Singing of our beloved motherland,
+From now on, marching towards prosperity and strength.*
 
-　　歌唱我们亲爱的祖国，从今走向繁荣富强。
+...
 
-　　……
+At first, it was one person, then many, and finally, everyone. The loud and clear song soared into the sky, echoing throughout the new world.
 
-　　起先是一个人，接着是许多人，最后是所有的人。高亢嘹亮的歌声直上云霄，响彻在新世界。
+"Sound the horn!" the Executive Committee ordered as they were about to enter the harbor.
 
-　　“鸣笛！”在即将进入港湾的时刻，执委会命令道。
+"Woooo—" The ship's horn blared. This was the horn of a civilization from another time-space, announcing the arrival of a new era—history was about to be changed.
 
-　　“呜——”汽笛声响彻着，这是来自另外一个时空文明的鸣笛，它宣告了新时代的来临——历史，即将被改变。
+Although everyone was eager to set foot in the new world, for the time being, they had to endure being on the ship until the pier construction was finished. Professional engineering personnel and unskilled basic laborers—the latter organized into groups of five—were transported ashore in batches on small boats.
 
-　　虽然每个人都在跃跃欲试的准备踏上新世界，暂时他们还得继续在船上忍耐直到码头工程结束。专业的工程人员和不专业的基本劳动力——后者按5人一组的编制，分批下到小艇上，运送上岸。
+The engineering personnel first had to plan and build a port area to serve as a base of operations for their advance inland.
 
-　　工程人员要先规划建设一个港区，作为向内陆挺进的出发基地。
+Bopu Port was not an ideal location for a seaport—although the bay had a deep-water channel of ten meters, and Hongshi Island and the estuary sandbars served as natural breakwaters, its shelter was not all-weather. It was almost completely exposed to the northwest, and when a northwest wind blew, the waves in the bay would be very large. The transmigrators could not use it as a main base. The annual storm surges caused by typhoons also made it unsuitable for settlement.
 
-　　因为博铺港作为一个海港来说地理环境并不优越——虽然海湾内有水深十米的深水航道，红石岛和河口淤积的沙洲也起到了天然防波堤的作用，但这里的避风条件却不是全天候的，西北面几乎全无遮蔽，一旦刮起西北风港湾内风浪会很大——穿越者无法把它作为主要基地使用，每年因为台风而引起的风暴潮也使得这里不适合安居乐业。
+The modern Bopu Port is located at the southern end of the bay, where the water is deepest. The engineering personnel also chose the same location as the landing site and cargo stacking area. Conventionally, such a port would require the construction of breakwaters, various forms of piers and jetties, unloading machinery, and large areas of warehouses and yards. All of this was a fantasy for the transmigrators.
 
-　　现代的博铺港是在海湾的南端，这里水深条件最好，工程人员也选择同一地点作为登陆地点和卸货堆积地。作为常规来说，一个这样的港口需要建筑防波堤，各种形式的码头和栈桥，卸货机械和大面积的堆货库房、场地。这一切对穿越者来说都是天方夜谭。
+Of course, they could also use the landing craft for ship-to-shore transport, but the speed was too slow. If they were to build a jetty manually, the construction period would be very long, and they would have to make some specialized equipment themselves to work effectively. Therefore, Yan Quezhi, who was in charge of port planning and design, and several other engineering technicians had discussed and decided before the transmigration to adopt the simplest method—a floating pier.
 
-　　当然，使用登陆艇也可以进行船－岸驳运，但是速度实在过于缓慢。如果人工修筑栈桥，整个工期很长，还必需自制一些专业设备才能有效的工作。所以负责港口规划设计工作的燕雀志和几位工程方面的技术人员在穿越前就商量好了采用最简单的办法——浮动码头。
+Floating docks are most commonly used in modern times for the berthing of small boats for passengers, and rarely as cargo unloading piers. However, anyone with a little knowledge of military history knows that the British and Americans used floating harbors on a large scale during the Normandy landings, allowing the Allies to land hundreds of thousands of tons of supplies and fifty thousand vehicles of various types on shore without capturing a port. Although the floating harbors were severely damaged in the subsequent hurricane and quickly lost their function, their effectiveness was fully proven.
 
-　　浮码头在现代运用最为常见的是小型船艇的上下客靠泊，很少用做卸货码头。不过稍了解一点军事历史的人都知道诺曼地登陆中英美就大规模的使用了浮动码头，使盟军在没有攻占港口的情况下将十万吨物资和五万辆各种车辆送上了岸。虽然浮动码头在随后到来的飓风中损失惨重，很快失去了作用。但其效用却被完全证明了。
+The transmigrators did not have such luxurious conditions—the Mulberry harbors at Normandy even had breakwaters—nor did they need such a large scale. They just needed to be able to transfer the materials and personnel from the ships to the shore as quickly as possible. Therefore, the floating pier was made of rows of sealed 200L iron drums, connected and welded with angle iron to form small units. The connecting parts of each unit were also hung with old tires for buffering. The top was then welded with corrugated steel plates. According to the engineering group's calculations, the buoyancy of each unit could support 40 tons. General vehicles, machinery, and materials could all pass through.
 
-　　穿越者们没有那么奢侈的条件——诺曼地的浮动码头还有防波堤，也不需要如此庞大的规模。他们只要能将船上的物资人员尽快转运到岸上就可以了。所以浮码头采用的是封闭的200L铁桶联排，再用角钢连接焊成小型的单元，各单元连接的部分还悬挂了缓冲用废轮胎，顶部再焊接上波纹钢板，根据工程组的测算，每个单元的浮力可承载40吨。一般的车辆、机械和物资都能通行了。
+The problem with this type of iron drum floating pier was the difficulty of connection. If they were standard pontoon bridges, they would have special connecting bolts and could be connected very accurately. Although these iron drum piers had outer frames welded with angle iron and pre-welded exposed steel lugs for connection, no one could guarantee the level of precision.
 
-　　这种铁桶浮码头单元的问题是连接困难。如果是制式舟桥，有专门的连接螺栓、可以非常准确的连接起来，这些铁桶码头虽然用角钢焊接了外框，也事先焊接了连接用的外露钢耳，但是这里的误差水平谁也不敢担保。
+The floating pier sections, towed by the fishing boats, were brought into the bay one by one. The transmigrators did not have the powerful motorized pontoons of combat engineers. The small motorboats on the *Fengcheng* had limited power. With several small boats towing and pulling, they finally managed to get the units roughly into position. The *Fengcheng* was anchored about 150 meters from the nearest point on the shore. The number of units was sufficient, but assembling them was much more difficult than imagined. The rise and fall of the waves made it difficult to align the connecting bolts. The engineering personnel had no experience in this area. In the chaos, people frequently fell into the water because they were too focused on their work. Fortunately, everyone had life jackets and whistles, and the landing command had organized a group of good swimmers to patrol the bay in rowboats to rescue them. The engineering department managed to avoid becoming the first department to have a martyr.
 
-　　由渔船拖带的浮动码头一个接一个的拖进了海湾，穿越者们没有舟桥兵的大马力机动舟，丰城轮上的小型机动艇马力有限，靠着几艘小艇连拖带拽，好不容易将一个个单元大致就位——丰城轮锚泊的泊位离开岸边最近处差不多整整150米，单元数量倒是足够，就是组合起来比想像当中还要费劲许多，波浪起伏使得连接得的螺栓很难到位，工程人员也没有这方面的经验，忙乱中不时有人因为过于专注干活掉下水去，幸亏都有救生衣和哨子，登陆指挥部又组织了一批擅长海泳的人乘坐划艇在海湾内来回巡视救助，工程部总算没成为第一个出烈士的部门。
+The grappling anchors, installed on the floating pier sections with reference to floating bridges, played a decisive role. The four small grappling anchors on each unit successfully reduced the pier's rocking. By late morning, a 150-meter-long, 8-meter-wide floating jetty had taken shape. Although cracks that could snap a person's ankle would still appear between the units as they rose and fell with the waves, accompanied by a terrible tearing sound.
 
-　　在制造浮码头时候参照浮桥安装的抓锚起了决定性的作用，每个单元上的四个小抓锚成功的减缓了浮桥的颠簸。上午即将结束的时候，一座长150米，宽8米的浮动栈桥已经成型，虽然这些单元在海浪的起伏中还是会不时露出可以夹断人脚踝的裂缝，并随之发出可怕的拉扯声。
+The members of the Executive Committee watched the completion of the transmigrators' first project from the *Fengcheng*, their hearts filled with irrepressible excitement. [Ma Qianzhu][y005] said loudly, "I propose that this jetty be named 'Project Number One' and that a monument be erected by the bridge to be recorded in the annals of the Transmigration Nation forever!"
 
-　　执委会的成员在丰城轮上看着穿越者的第一个工程完工，心里按捺不住的激动，[马千瞩][y005]大声说：“我建议这个栈桥命名为‘一号工程’，在桥边要树碑立传，永垂穿越国的史册！”
+"A monument is fine," said [Wen Desi][y002]. "But this thing must be replaced with a permanent facility before the typhoon season next year. If a typhoon comes and blows it away, our losses will be great—so many iron drums and steel!"
 
-　　“立碑可以。”[文德嗣][y002]说，“不过这个东西在明年台风前之前就得用永久性设施替换掉，台风一来，把它刮走了我们损失就大了——这么多的铁桶和钢材！”
+[Ma Qianzhu][y005] was about to speak when suddenly a foreign woman burst into the wheelhouse, snapping pictures furiously with a camera. Everyone was stunned for a moment, then they remembered that this was Ding Ding's Western girlfriend, Panpan. Then Ding Ding also came in, holding a voice recorder, and immediately asked [Ma Qianzhu][y005] to talk about his feelings on the landing. This restless media reporter had already gathered a few people who knew printing and was preparing to publish the transmigrators' first newspaper. He had even allocated the shares and given his future newspaper a completely uncreative name: the *Lingao Times*.
 
-　　[马千瞩][y005]正想说话，忽然驾驶室里钻进来一个洋妞，拿着个照相机喀嚓喀嚓的一阵猛拍，大伙都是一愣，这才是想起这是丁丁的大洋马女朋友潘潘，接着丁丁也进来了，手里拿着个采访机，直接就要[马千瞩][y005]谈谈登陆的感想——这位不甘寂寞的传媒记者已经拉拢了几个懂印刷的，准备出穿越者的第一张报纸，他连股份都分配好了，还给自己未来的报纸取了一个毫无创造力的名字《临高时报》。
+"No feelings," [Ma Qianzhu][y005] said with an uncooperative attitude. In fact, his heart was surging with emotion today, but he just didn't like this kind of interview. He would rather write his memoirs quietly and mention his feelings then, rather than being poked with something and asked.
 
-　　“没什么感想。”[马千瞩][y005]一脸不合作的态度。其实他今天心潮澎湃的很，就是不喜欢采访这类玩意，他更愿意安安静静的写回忆录的时候再提自己的感想，而不是被人用某个东西戳着问。
+"What about [Director Wen][y002]? Your thoughts?" Ding Ding immediately switched targets. Panpan came over and started snapping pictures of [Wen Desi][y002].
 
-　　“[文总][y002]呢？谈谈你的看法。”丁丁马上转换对象，潘潘过来又是对着[文德嗣][y002]一阵猛拍。
-
-　　“历史性的一天。”[文德嗣][y002]说。
-[y002]: /characters/y002 "文德嗣"
+"A historic day," said [Wen Desi][y002].
+[y002]: /characters/y002 "Wen Desi"
 [y005]: /characters/y005 "马千瞩"
