--- a/_posts/2009-10-21-2-00400.md
+++ b/_posts/2009-10-21-2-00400.md
@@ -1,83 +1,72 @@
 ---
 layout: post
-title: 第四节 港口建设（一）
+title: "Section 4: Port Construction (Part 1)"
 category: 2
 path: 2009-10-21-2-00400.md
 tag: [normal]
 ---
 
-　　D日的开始，如果用一个局外人的眼光来看，即混乱又壮观。保持着原始亚热带海湾风景的港湾里，到处是突突着来回奔波的小艇，船舶上的吊杆不断的起降着货物，密密麻麻的人群正从巨大的轮船上攀附着舷梯下船，沙滩上到处竖立起不同颜色的牌子，指示着人、车、设备的登陆地点、堆货处、联络处、登记处等等。
+From an outsider's perspective, the beginning of D-Day was both chaotic and spectacular. The harbor, which had maintained its pristine subtropical scenery, was now bustling with small boats shuttling back and forth. The derricks on the ships continuously lifted and lowered cargo. A dense crowd of people was disembarking from the huge ship via the gangway. The sandy beach was dotted with signs of different colors, indicating landing sites for personnel, vehicles, and equipment, as well as cargo dumps, liaison points, and registration desks.
 
-　　整个港区的营地的是以博铺巡检司和其后面的烽火台为中心拓展出去。从港口未来发展的角度来看，这个地点并不理想，红树林一直延伸到海边，四面也不够开阔。但是巡检司现成的房屋和烽火台这个人工制高点却是穿越众难得的有利条件。不过这房子里大明官兵虽然落荒而逃，另一种生物却给穿越众们带来了小小的麻烦。
+The entire camp in the port area was centered around the Bopu Inspection Office and the beacon tower behind it. From the perspective of future port development, this location was not ideal. The mangrove forest extended all the way to the sea, and the surrounding area was not open enough. However, the existing buildings of the inspection office and the artificial high ground of the beacon tower were rare advantages for the transmigrators. But while the Ming officials and soldiers had fled in disarray, another kind of creature brought a small bit of trouble to the transmigrators.
 
-　　凌晨军事组刚占领这房子不久，搜索工作还没结束，就有好几个人被房子里的跳蚤咬得逃出来了——旧式的砖木结构房屋内虫害滋生，跳蚤臭虫基本就是常客。在40年代DDT和666被大规模生产使用之前，只要是老旧房屋，又特别是木结构房屋内，寄生虫都是长期住户。1945年，意大利的那不勒斯还因为跳蚤传播的原因爆发过斑疹伤寒。幸亏美军大量喷洒DDT，消灭了宿主才遏制了这次疫病流行。自此以后世界上的大多数城市才摆脱了困扰千百年的这几样寄生虫问题。
+Shortly after the military group occupied the building at dawn, before the search was even complete, several people were bitten by fleas in the house and had to flee. Old-style brick and wood structures were breeding grounds for pests, and fleas and bedbugs were common residents. Before the large-scale production and use of DDT and BHC in the 1940s, parasites were long-term inhabitants of any old building, especially wooden ones. In 1945, Naples, Italy, even had an outbreak of typhus spread by fleas. Fortunately, the US military sprayed large amounts of DDT, eliminating the hosts and curbing the epidemic. Only since then have most cities in the world been freed from the problem of these parasites that had plagued them for millennia.
 
-　　作为卫生组的负责人，时袅仁在卫生预案里早就预料到了这样的情况。带队的卫生防疫队就紧跟着登陆了，全身防护衣长统靴，口罩风镜，背着喷药桶的防疫队让军事组产生了七三一的联想，这群人进到屋子里就猛喷药水。
+As the head of the health group, Shi Niaoren had long anticipated such a situation in his sanitation plan. The epidemic prevention team he led landed right after, dressed in full protective clothing, high boots, masks, and goggles. The team, carrying sprayers on their backs, reminded the military group of Unit 731. They entered the houses and began spraying insecticide vigorously.
 
-　　医疗卫生组用6％可湿性六六六调制成150倍的水悬液，喷洒在房内的各个角落和家具上，然后紧闭房屋门窗30分钟，以杀灭房屋内的跳蚤、臭虫和其他害虫。房内的各种破烂家什：席子被褥衣服等物统统被搬出来丢在海滩上一火焚之。至于进过屋的几个军事组成员，也被毫不客气的先用药水液从头到脚彻底的喷淋了一遍，再打发回大船上去洗澡。每个人身上还被别了一个卫生组特制的橙红标签，意思是轻度感染者。
+The medical and health group used a 150x water suspension of 6% wettable BHC, spraying it in all corners of the rooms and on the furniture. Then they sealed the doors and windows for 30 minutes to kill the fleas, bedbugs, and other pests inside. All the dilapidated furniture in the rooms—mats, bedding, clothes, etc.—was carried out and burned on the beach. As for the few military group members who had entered the houses, they were unceremoniously sprayed from head to toe with the insecticide solution and then sent back to the main ship for a bath. Each of them was also pinned with a special orange-red tag made by the health group, indicating they were lightly infected.
 
-　　熏蒸半小时接着又通风一小时结束后，登陆指挥部立刻就占据了这所小院的三开间正厅作为办公室，两侧的厢房弓兵的宿舍也被清理干净，作为机房和贵重物品的仓库。
+After half an hour of fumigation followed by an hour of ventilation, the Landing Command Post immediately occupied the three-bay main hall of the small courtyard as its office. The side rooms, which had been the archers' dormitories, were also cleaned out and used as a server room and a warehouse for valuable items.
 
-　　房屋里依旧散发着弥漫着浓烈的六六六消毒水的气味。不过对于指挥部来说这一切都不算什么，电台被架设起来，桌子上铺设了地图，随即，依靠电池组的电力，服务器开始工作，无线局域网被架设起来，通过信号放大器天线，各个登陆地点和卸货点的笔记本电脑都可以直接和服务器传递数据了。潮水一般的数据开始源源不断的涌入服务器：人力组在各个登陆点设置了登记点，记录穿越众者上岸情况，计委在卸货点和堆货点也派出了扫描人员，开始纪录资材设备的入库出库。
+The strong smell of BHC disinfectant still permeated the rooms. But for the command post, none of this mattered. The radio was set up, maps were spread out on the tables, and soon, powered by battery packs, the server started working. A wireless local area network was established. Through signal amplifier antennas, the laptops at various landing sites and unloading points could now directly transmit data to the server. A tide of data began to flow continuously into the server: the human resources group had set up registration points at each landing site to record the disembarkation of the transmigrators. The planning commission had also dispatched scanning personnel to the unloading and stacking points to start recording the entry and exit of materials and equipment.
 
-　　丰城轮上，被编入各个组的穿越者们正在排队按人力组的安排逐组下船，山寨版的美军背包压得人喘不过气来，这还是配发装备，私人行李此刻还在底舱睡大觉——按卸载级别要轮到最后。
+On the *Fengcheng*, the transmigrators, organized into various groups, were lining up to disembark group by group according to the human resources group's arrangement. The knock-off US military backpacks were so heavy they were suffocating. This was just the issued equipment; their personal luggage was still sleeping in the bottom hold, scheduled to be unloaded last.
 
-　　船上的高音喇叭里正反复宣读着执宣字：16280002号文件：
+The ship's loudspeakers repeatedly broadcast Executive Committee Directive No. 16280002:
 
-　　1、一切行动听指挥，不得擅自行动。
+1.  All actions must follow command; no unauthorized actions are permitted.
+2.  No one may cross the camp perimeter without permission. Those who need to for tasks must register at the perimeter guard post when entering and exiting.
+3.  No urinating, defecating, or littering in random places. Garbage must be sorted and disposed of in designated garbage pits.
+4.  Food and water must be obtained from designated supply points. No private hunting, fishing, or consumption of game is allowed.
+5.  If you notice any abnormality in your own or others' health, you should seek help from the medical point immediately.
 
-　　2、非经许可，任何人不得超越营地警戒线。有任务需要的，在穿越警戒线时必需从警戒值班点登记出入。
+To use labor rationally, dispatch personnel efficiently, and avoid having some people working while others are idle, the Landing Command Post invented an armband system.
 
-　　3、不得随地大小便、抛弃垃圾，垃圾必需分类抛弃在指定垃圾坑内。
+*   **Red:** Military group security personnel.
+*   **Blue:** Ship-based personnel and those remaining on board. The armband had a white circle in the center, with a Chinese character printed on it to indicate the ship type: Freighter, Barge, Fishing, Landing, Boat, or Miscellaneous. People unable to participate in labor for various reasons, such as the sick and children, used this blue armband with a white miscellaneous character.
+*   **White:** Professional technical personnel responsible for various construction projects on D-Day.
+*   **Yellow:** Command and administrative personnel under the Landing Command Post system.
+*   **White with numbers:** These belonged to the "basic laborers." The armband was printed with a 4-digit number. All "basic laborers" were free to form groups of five, with each group having a 4-digit code. The group leader had a work manual for their group. Each time they accepted a new job, the staff would make a relevant record in the manual and also register the tools and equipment issued for the job.
 
-　　4、必须在指定食水供应点获取食物和水，不得私自打猎、捕鱼和食用猎物。
+The dispatch of work was uniformly scheduled by the human resources group of the Landing Command Post. In the human resources group's tent, there was a large table with a large-scale map of the Lingao Cape-Bopu Port area spread out on it, covered with transparent paper. The various professional groups and labor groups were represented by numbered cards of different colors, placed in the areas where they were working. After dispatching a job, the human resources group would clip hairpins symbolizing the labor intensity onto the card—one for light, two for medium, and three for heavy—to avoid large disparities in labor intensity between the groups.
 
-　　5、发觉自身或者他人身体有任何异常，应迅速向医疗点求助。
+Although this icon system was simple, when used in conjunction with the labor management system in the OA system, not only could the human resources group clearly know the current work content, location, and workload of each group, but they could also see what tools and how much material each group had received. This greatly facilitated the dispatch and management of labor.
 
-　　为了合理使用劳动力，有效率的分派人员，避免有人干活有人发呆，登陆指挥部发明了一个臂章带体系。
+On the sandy beach south of the harbor, a large military tent was temporarily set up. A sign was erected at the entrance with a few crookedly painted characters: "Bopu Port Area Construction Command Post." All the technical personnel in architecture, planning, design, and hydrology among the transmigrators were gathered here. The "Project Number One" they had just completed was now in full swing. Various engineering equipment and materials were being continuously unloaded via the floating pier. With a material basis, the construction of the port area base naturally had to be fully launched.
 
-　　红色：军事组警戒人员。
+Inside the tent was a conference table and folding chairs taken from the ship. On the table were laptops and many bound volumes of hydrographic data. Although there were technical personnel from all fields here, everyone's main focus was on the four people leaning over the map at the table:
 
-　　蓝色：船舶留守及使用人员。臂章中心有白圈，按船舶类型不同，用汉字印上：轮、驳、渔、登、艇、杂六种字符。因为各种原因无法参加劳动的人，如病人、儿童使用这个蓝底白杂字臂章。
+*   **Bing Feng**, 27, a hairy young man who was a structural engineer with a project manager certificate. He specialized in the design and construction of portal steel frame factory buildings and steel structure residences.
+*   **Yan Quezhi**, 28, chubby, a product of Chinese-style university education who knew a little about everything but was a master of none. He had a diploma in hydrology and was a semi-professional technician in water conservancy, hydrology, and meteorology. He knew a lot about hydrology, understood surveying, could skillfully use levels and theodolites, and had a slight understanding of hydraulic engineering structures.
+*   **Mei Wan**, 30, an old hand who had been in the construction industry for many years after graduating with a degree in architecture. He specialized in project cost and management. He was proficient in using various measuring tools and had rich experience in the management and coordination of civil engineering.
+*   **[Li Xiaolü][y156]**, 30, a professional planning designer with architect and planner certificates. Surveying and planning were her specialties.
 
-　　白色：负责D日当天各项工程建设的专业技术人员。
+These were the so-called "Four Great Heavenly Kings" of the architectural engineering group. Of course, [Li Xiaolü][y156] was a woman, but no one could compare to her in terms of the number of certificates she held. However, she had little practical experience in construction and did not like to be in the limelight. So, Mei Wan was the leader of the four. After all, he had spent the most time on construction sites and knew a little about everything.
 
-　　黄色：登陆指挥部体系下的指挥及行政人员。
+"The command post requires us to complete the basic infrastructure construction of the port area before dark today: power supply, water supply, setting up unloading and stacking yards, and completing simple fortification work," Mei Wan relayed the instructions. "We have priority use of materials, machinery, and labor."
 
-　　白色号码臂章的，一律属于“基本劳动力”，臂章上印有一排4位数字号码。所有“基本劳动力”按五人一个小组自由组合，每个小组各有一个4位数编码。组长领有本组工作手册，每接受一项新工作，工作人员就在手册上做相关纪录，同时将因为工作需要发给的工具装备登记在册。
+"Team Leader Mei, we haven't even done the surveying yet, so we can't produce a planning map. I've compared the surveying data we brought, and the terrain here is quite different from the 21st century," said [Li Xiaolü][y156].
 
-　　派工的事务，由登陆指挥部的人力组统一调度，在人力组的帐篷里有一张大桌子，一张事先打印好的临高角——博铺港地区大比例地图铺开在桌面上，上覆盖着透明纸。各个专业组、劳工组以不同颜色的号码卡片代表，放置在他们正在进行的工作区域。根据工作内容的不同，人力组派工之后卡片上都要将象征劳动强度的发卡卡上去，一根为轻度、二根为中度，三根为重度，以避免各小组之间的劳动强度差别过大。
+"There's no time for too much detail," Mei Wan said. "Fortunately, this is not our main construction base, so it doesn't require too much planning. We'll focus on small-scale temporary projects."
 
-　　这套图标系统虽然简单，但是和OA系统中的劳动管理系统配合起来使用，不仅人力组可以清楚地知道每个小组目前的工作内容，工作地点、劳动量多少，连每个组领取过什么工具，多少资材都一清二楚。极大的方便了劳动力的调派和管理
+"We'll survey, design, and construct at the same time," Mei Wan, having been on construction sites, was very familiar with how to rush a project. He immediately divided the work. [Li Xiaolü][y156] and Yan Quezhi were responsible for the surveying work of the port area. Surveying was both a technical and a physical job, so another basic labor group was assigned to them as assistants. At the same time, the military group issued them a five-shot shotgun for self-defense.
 
-　　港湾南面的沙滩上，临时搭起了一个大型军用帐篷，门口竖起了一块牌子，上面是七弯八扭的几个油漆字：“博铺港区建设指挥部”。这里云集了穿越者中的所有建筑、规划、设计、水文各个方面的技术人员。他们刚刚完成的一号工程现在已经发挥起作用。各种工程设备和物资正在通过浮码头不断卸载——有了物质基础，港区基地的建设自然也要全面铺开。
+Tian Jiujiu was responsible for the water supply and drainage of the camp area, [Chang Kaishen][y010] was responsible for the power supply business, and as for Bing Feng, his task was the most arduous: building the cargo stacks.
 
-　　帐篷里摆了一张从船上拿下来的会议桌和折叠椅，桌子上摆着笔记本电脑和许多装订成册的水文资料集。尽管这里各方面的技术人员都有，但是大家的主要目光还是落在紧靠桌子看地图的四个人身上：
+In comparison, [Chang Kaishen][y010]'s business was relatively easy. The Executive Committee had prepared all kinds of power generation devices and many supporting power transmission and transformation equipment, but at this moment, these things were still sleeping in containers. As a temporary port camp, there were few points of electricity consumption and the overall load was small: mainly for lighting, office electricity for the command post, and a few electric loading and unloading machinery. The power load was relatively small.
 
-　　冰风，27岁，这个毛发浓密的小伙子是结构工程师。有项目经理证。擅长的是门式钢架结构厂房和钢结构住宅设计、施工。
+Based on this demand, this simple early version of the power grid should strive for simplicity, reliability, ease of operation, and minimal use of materials. Therefore, [Chang Kaishen][y010]'s plan was not to build a power station on shore, but to draw power directly from the auxiliary engine of the *Fengcheng*. Although the main engine of the ship was stopped after anchoring, the auxiliary engine was still running, providing energy for the entire ship. The power group would directly pull a 380-volt cable from the ship's distribution room, fix it along the floating pontoon bridge, and extend it to the shore-based distribution station for power distribution. The entire power grid used the simplest radial connection method. This connection method was also the most common method in China's rural power grids in the past. Its disadvantage was that when a line failed or was under maintenance, the power supply to all users on the line had to be temporarily stopped. However, this was still acceptable under the current circumstances. The only thing that needed an uninterrupted power supply was the operation of IT equipment in the office, which could be met by using a UPS backup power supply + high-power battery packs.
 
-　　燕雀志，28岁，胖乎乎的，属于中国式大学教育培养出来的什么都懂，什么都不精的人才。水文学大专毕业，半吊子水利、水文、气象技工。水文的知识了解比较多，懂测绘，能熟练使用水准仪、经纬仪，略懂水利工程结构。
-
-　　梅晚，30岁，建筑专业毕业后在建筑公司混迹多年的老混子，专门负责工程造价和管理。会熟练使用各种测量工具，对土木工程的管理和协调也有丰富的经验。
-
-　　[李潇侣][y156]，30岁，职业规划设计人员，有建筑师和规划师证，测绘和规划是她的本行。
-
-　　这就是号称建筑工程组的四大金刚。当然[李潇侣][y156]是女的，但是论到持证之多，谁也比不上。不过她很少施工方面的实际经验，而且不喜欢抛头露面。所以四大金刚就以梅晚为主。毕竟他在工地上时间最长，方方面面都懂一些。
-
-　　“指挥部要求我们在今天天黑前完成港区的基本设施建设：通电、供水、设置卸货场和堆货场。完成简单的设防工作。”梅晚传达着指示，“我们拥有物资、机械和劳动力的优先使用权。”
-
-　　“梅组长，我们连测绘都没做，出不了规划图。我对照了带过来的测绘资料，这里地形和21世纪差别挺大的。”[李潇侣][y156]说。
-
-　　“没时间做太细了。”梅晚说，“好在这里并不是我们建设的主基地，不需要太多的规划。以小型临时性的工程为主。”
-
-　　“我们边测绘边设计边施工好了，”梅晚到底是工地上混过的人物，对如何赶进度熟得很。当下作了分工，[李潇侣][y156]和燕雀志负责港区的测绘工作，测绘工作即是技术活也是体力活，所以再拨给一个基本劳力小组作辅助工，同时由军事组发给5连发猎枪一支作为防身用。
-
-　　田九九负责营区的给排水工作，[常凯申][y010]负责送电业务，至于冰风，他的任务最为艰巨，建造货物堆栈。
-
-　　相形之下，[常凯申][y010]的业务比较容易。执委会准备了各式各样的发电装置，还有许多配套的输变电设备，但是此时此刻这些东西还在集装箱里睡大觉。作为临时性的港口营地，用电点少，整体负荷小：主要满足的是照明用电、指挥部的办公用电和少数电动装卸机械设备。用电负荷较小。
-
-　　根据这样的需求，这个简单的早期版供电网应该力求简单可靠，操作方便和尽量少用资材。因此[常凯申][y010]的方案是不在岸上建立发电所，而是直接从丰城轮的辅机上取电——轮船下锚之后主机虽然停止，但是辅机还是一直运转着，为整个轮船提供能源。电力组便直接从船上配电间拉出一根380伏电缆，沿着浮动舟桥布线固定，一直延伸到岸上的配电所进行配电。整个供电网使用最为简单的放射形接线方式。这种接线方式也是过去中国农村电网中最常见的方式。它的缺点是线路发生故障或者检修的时候，就必需暂时停止对线路上所有用户的供电。不过这在目前的状况下还是可以允许的。唯一需要不间断供电的只有办公用电中的IT设备运转，那么使用UPS备用电源＋大功率蓄电池组也可以满足了。
-
-　　不过在实际的工程里，将输电缆直接固定在浮动栈桥上的设计被推翻了，执委会的意见是可能会漏电，不安全，而且线路固定在人车反复来往的栈桥上，可能在无意间被人为的损坏。工程组随即变更了设计，他们拆开了一组备份的浮动单元，用钢丝绳把这些空桶单独串联起来，浮在水面上。每个桶上还悬挂了配重物，保持其在水面上漂浮的稳定性。这条原打算用来输电的水上线路很快就发挥了更大的作用：首先是架设起了从船上抽取柴油的浮动输油管，然后是通讯组将船上的电话线直接拉到了岸上。这样，丰城轮就可以不使用步话机而直接和指挥部进行电话联系甚至发传真了。最大的好处是IT组的石开利用这条电话线，实现了网络连接，现在岸上的所有电脑都可以通过登陆指挥部的服务器直接访问船上的服务器双向传送资料了。OA系统实现了全面覆盖。
+However, in the actual project, the design of directly fixing the power cable to the floating jetty was overturned. The Executive Committee's opinion was that it might leak electricity, was unsafe, and the line being fixed on the jetty with frequent traffic of people and vehicles could be unintentionally damaged. The engineering group immediately changed the design. They dismantled a set of backup floating units and strung the empty barrels together with steel wire ropes, floating them on the water. Each barrel was also hung with a counterweight to maintain its stability on the water. This floating line, originally intended for power transmission, soon played a greater role: first, a floating fuel pipe was set up to draw diesel from the ship, and then the communications group pulled the ship's telephone line directly to the shore. In this way, the *Fengcheng* could directly contact the command post by phone and even send faxes without using a walkie-talkie. The biggest benefit was that the IT group's Shi Kai used this telephone line to realize a network connection. Now all the computers on shore could directly access the server on the ship through the landing command post's server to transmit data in both directions. The OA system had achieved full coverage.
 [y156]: /characters/y156 "李潇侣"
 [y010]: /characters/y010 "常凯申"
