--- a/_posts/2009-10-24-2-00700.md
+++ b/_posts/2009-10-24-2-00700.md
@@ -1,72 +1,76 @@
 ---
 layout: post
-title: 第七节 厕所
+title: "Section 7: The Latrine"
 category: 2
 path: 2009-10-24-2-00700.md
 tag: [normal]
 ---
 
-　　“从你拿出那把油锯出来，我就知道中国的环境没有未来了！”在第三届全国环保工作会议上，戴谐的发言揭开了对林业部长吴旷明的批斗狂潮，在林业战线上奋战二十多年的吴旷明同志不得不在会上做出深刻检讨后黯然离职，转而就任林业大学任校长。但倒退回三十年前的那一天，他可是被执委会称为“一个人干了一个小组定量”劳动英雄——当然他能干这么多，主要是其他伐木工太废柴，倒不仅是油锯的功劳。
+"From the moment you pulled out that chainsaw, I knew there was no future for China's environment!" At the Third National Environmental Protection Work Conference, Dai Xie's speech kicked off a firestorm of criticism against the Minister of Forestry, Wu Kuangming. Comrade Wu Kuangming, who had fought on the forestry front for more than twenty years, had to make a profound self-criticism at the meeting before resigning sadly, subsequently taking up the post of president of the Forestry University. But back on that day, thirty years earlier, he was hailed by the Executive Committee as a labor hero who "did the work of an entire team by himself"—of course, his high productivity was mainly due to the other loggers being too useless, not just the merit of the chainsaw.
 
-　　油锯当然不止一把，但是谁也不敢贸然去问津这可能随时断裂肢体的玩意。吴旷明突击培训了二个，又给大家演示了一下用斧子砍树的技巧：先抡着斧子，围着树干接二连三的转圈砍着，切口渐渐深入树心，树一开始晃动，就马上站在上侧面，一面用斧头顶树，一面喊。树木就倒下去了，看起来是一点也不难，但是这里牵涉到人的臂力和用斧技巧，并不是那么容易的。他自己一边砍，一边随口指点着周围的人。
+Of course, there was more than one chainsaw, but no one dared to venture near the contraption that could sever a limb at any moment. Wu Kuangming gave a crash course to two people and then demonstrated the technique of felling a tree with an axe: first, swing the axe and circle the trunk, cutting repeatedly. The cut gradually deepened towards the heart of the tree. As soon as the tree began to sway, he immediately stood to the side, pushing the tree with the axe while shouting. The tree fell. It looked easy, but it involved arm strength and skill with an axe, which was not so simple. As he chopped, he casually gave pointers to the people around him.
 
-　　各个伐木组沿着林线砍伐，斧头咔咔响着，拉锯的嗤嗤声此起彼落。时而有人大喊一声，一棵大树倒下。砍伐这一行对这些过去的现代人来说是艰苦的，多数人是外行，斧头抡的很猛，砍下去却不深，拉起锯来，不是夹锯就是别锯，非常吃力，半天也拉不倒一棵，倒把锯子和斧子用坏了不少。把计委管物资工具分发的几个人脸拉得老长。
+The various logging groups felled trees along the forest line. The thud of axes and the hiss of saws rose and fell. From time to time, someone would shout, and a large tree would fall. Logging was arduous work for these modern people. Most were amateurs; they swung their axes fiercely, but the cuts were not deep. When they used a saw, it would either get stuck or bind, making it extremely strenuous. They could barely fell one tree in half a day, but they managed to break quite a few saws and axes, making the faces of the people in the Planning Commission in charge of distributing materials and tools grow long.
 
-　　吴旷明拿着油锯，和大家一起干着。他其实也不算内行，油锯拿着很吃力，油锯自重大，开动起来又需要很大的力气来稳定，砍倒一棵树，每每累得满头大汗。
+Wu Kuangming, holding his chainsaw, worked alongside everyone. He wasn't really an expert either. The chainsaw was heavy, and it took a lot of strength to keep it stable when it was running. After felling a tree, he was often drenched in sweat.
 
-　　他不放心的到各处去察看，一棵大海莲下，绍宗和胡义成正在拉锯，一拉一送很吃力，在并不炎热的阳光两个人已经是气喘如牛了。他提醒他们：“小心，别折断了锯条。计委那帮人脸都臭了。”
+He restlessly went around to inspect the work. Under a large *Bruguiera* tree, Shao Zong and Hu Yicheng were sawing, pulling and pushing with great effort. In the not-so-hot sun, both men were already panting like bulls. He reminded them, "Be careful, don't break the saw blade. The guys at the Planning Commission are already looking pissed."
 
-　　胡仪成叹了一口气说：“绝望了！执委会有眼无珠！好歹属于高精尖方面的人才，要我拉大锯！同学要知道我这么研究生物，准得把牙都笑掉。”
+Hu Yicheng sighed and said, "I've lost all hope! The Executive Committee is blind! I'm a high-tech talent, and they have me pulling a saw! If my classmates knew I was researching biology like this, they'd laugh their heads off."
 
-　　吴旷明说：“内行使巧劲，外行只有花力气了，学着干吧。要你们用油锯又个个推脱！”
+Wu Kuangming said, "Experts use skill, amateurs can only use brute force. Just learn as you go. When I offered you the chainsaw, you all refused!"
 
-　　“别，我的胳膊和腿还想留着，那玩意我是玩不了。”
+"No way, I want to keep my arms and legs. I can't handle that thing."
 
-　　“我这体格，当德州电锯杀人狂恐怕第一个就得把自己卸下几块来。”绍宗愁眉苦脸的拉着锯子，“本来想到通讯组能轻松点，亲手搭建起中国电信来，没想到先来准备电线杆子了。”
+"With my physique, if I were to become the Texas Chainsaw Massacre killer, I'd probably chop off a few pieces of myself first," Shao Zong said with a愁眉苦脸 as he pulled the saw. "I originally thought the communications group would be easier, that I could build China Telecom with my own hands. I didn't expect to be preparing telephone poles first."
 
-　　吴旷明刚想说些什么给他们鼓点劲，忽听有人尖叫一声：“妈呀！有蛇。”还没等反应过来，就看到三四个人失魂落魄的从树林边连滚带爬的逃了过来，手里的斧子锯子丢了一地。
+Just as Wu Kuangming was about to say something to encourage them, he suddenly heard someone scream, "Oh my god! A snake!" Before he could react, he saw three or four people scrambling and crawling out of the woods, having lost their wits, their axes and saws dropped all over the ground.
 
-　　赶紧拦住这几个，哥几个还惊魂未定，一个个话都说不利索了。吴旷明很鄙视了这几个城市宅男一把——伐木工遇到蛇那是再正常不过的事情，他听一个当过林业工人的父辈朋友说过，晚上在林子里过夜，床辅都得抖过，秋天天一冷，蛇类都往工人的窝棚里钻，得拿烟熏过才能进去睡觉。
+He quickly stopped them. The guys were still in shock, unable to speak coherently. Wu Kuangming looked down on these urban otaku—it was perfectly normal for a logger to encounter a snake. He had heard from an elder friend who had been a forestry worker that when they spent the night in the forest, they had to shake out their bedding. In the autumn, when it got cold, snakes would crawl into the workers' sheds, and they had to smoke them out before they could go to sleep.
 
-　　红树林这样的半沼泽环境，不用说也是爬行动物的活动区，所以他才给这些伐木工们都配备了长统雨靴——不是为了防水。
+The semi-swampy environment of the mangrove forest was, needless to say, also a habitat for reptiles. That was why he had equipped all the loggers with high-top rain boots—not for waterproofing.
 
-　　柳正倒来了精神，随手从砍削下的枝叶堆里选了个叉头棍子，对吴旷明说：“组长，我去看看，逮着了晚上做个加餐。”
+Liu Zheng, however, perked up. He casually picked a forked stick from a pile of cut branches and said to Wu Kuangming, "Team leader, I'll go take a look. If I catch it, we'll have an extra dish for dinner tonight."
 
-　　吴旷明说：“执委会不是说不许吃野生动物吗？”
+Wu Kuangming said, "Didn't the Executive Committee say we're not allowed to eat wild animals?"
 
-　　“管他个球。这么纯天然野生的货色，怎么能不吃。”野外探险对柳正来说就是职业，剐条倒霉落在他手里的蛇加个餐更是家常便饭。他估摸着他们遇到的应该是广东常见的水律、过树榕这类，也可能是毒蛇，饭铲头、过基峡之类。他一则平时捉得多了，二则装备齐全，背包里还塞了好几瓶季德胜蛇药，带着棍子兴冲冲的沿着逃跑路线进去了，结果转了一圈，什么也没找到，吴旷明怕他走的太深了迷路，赶紧又把他叫了出来。
+"To hell with them. How can we not eat such a pure, natural, wild thing?" Wilderness exploration was a profession for Liu Zheng, and skinning an unlucky snake that fell into his hands for an extra meal was commonplace. He guessed they had probably encountered a common Guangdong water snake or a rat snake, or possibly a venomous snake like a cobra or a krait. He was experienced in catching them, and he was well-equipped; his backpack even contained several bottles of Jidesheng snake medicine. He excitedly took the stick and followed the escape route into the woods. But after searching for a while, he found nothing. Wu Kuangming, afraid he would go too deep and get lost, quickly called him back.
 
-　　这边正说着话安抚受到惊吓的穿越男们，顺便进行安全教育，那边又有树枝劈裂的声音，接着一声惨叫，忙转过脸一看，一个人被砍倒的树刮倒了，赶紧跑过去。小伙子一脸的血，躺在地上疼得哼哼唧唧的，吓得四周的几个人都不知所措。幸好沙滩上一直有卫生组的人在巡逻，步话机一呼叫，一辆插着红十字旗的黄色小农用车就来了，简单看了下认为没大碍，是撕裂伤，包扎处置了直接拉车上送走了。
+While he was talking to and calming down the frightened transmigrator men, and giving a safety lesson at the same time, there was a sound of a branch splitting, followed by a scream. He quickly turned his head and saw that a person had been knocked down by a felled tree. He rushed over. The young man's face was covered in blood, and he was lying on the ground, groaning in pain. The few people around him were so scared they didn't know what to do. Fortunately, there were always health group members patrolling the beach. A call on the walkie-talkie brought a small yellow farm truck with a Red Cross flag. A quick examination determined it was not a major injury, just a laceration. After dressing the wound, they put him on the truck and sent him away.
 
-　　这事情让吴旷明感到不安，说到底他对伐木这活也不是很熟悉。自己又是第一次带这么多人干危险性高的活。登陆以来，出了人身伤亡事故的他这里还是头一个，这个纪录可是不光彩呀。他无心干活了，拎着油锯到处检查，叮嘱大家注意安全，看到实在砍得不得法的，直接拿油锯上去解决。
+This incident made Wu Kuangming uneasy. After all, he wasn't very familiar with logging himself. And it was his first time leading so many people in such a dangerous job. This was the first personal injury accident since the landing, a dishonorable record. He lost the heart to work, carrying his chainsaw around to inspect, urging everyone to be careful. When he saw someone who really didn't know how to chop, he would go up and solve the problem with his chainsaw.
 
-　　采伐下来的木材被简单的拖到沙滩上打筒，枝叶也被堆在一边等候利用。刚采伐的树木含水量过多没法加工，马上利用的话很快就会干缩变形，甚至引起霉烂等病虫害。一般都要进行一定时间的干存去除多余水分或者人工烘干。穿越者此时没有烘干设备，好在眼下不打算造什么长期建筑，几座塔楼和一排厕所都属于临时性的东西，用湿木头也无所谓。
+The felled timber was simply dragged to the beach and trimmed. The branches and leaves were also piled to one side for later use. Freshly cut wood has too high a moisture content to be processed. If used immediately, it will soon shrink and deform, and even cause mold and pest problems. Generally, it needs to be dry-stacked for a period of time to remove excess moisture or be artificially dried. The transmigrators had no drying equipment at the moment, but fortunately, they were not planning to build any long-term structures right now. The few watchtowers and a row of toilets were all temporary, so using wet wood was acceptable.
 
-　　戴谐深深地吸了一口气，略带咸味的清新海风沁入心脾。这里的海水与自己的那个时代并没有太大的差别，也许就因为这是大海吧，孕育生物的摇篮，自身的洁净能力自然要远远高于那些受不得工业污染的江河了。
+***
 
-　　也许真的有鬼使神差这么一说，不然怎么也不能解释自己这样一个普普通通的上班族会参与这么一个逆天的计划，甚至没有留下一份象样的遗书就不告而别。原本是为了不让家人担心而选择的默默离开，但是真的就这样轻轻割裂了二十多年亲情，细细思虑也觉得自己未免有些薄性了。但是事已至此，已经无法回头了，在亲眼看到那个薄薄的镜面化为一阵白光消失后。戴谐明白，从此，所有现世的一切都被抛弃了，包括自己和同志们只剩下一个决心——“建立新世界”。
+Dai Xie took a deep breath. The fresh, slightly salty sea breeze was refreshing. The seawater here was not much different from that of his own time. Perhaps it was because this was the ocean, the cradle of life, and its self-cleaning ability was naturally far greater than that of rivers that could not withstand industrial pollution.
 
-　　因为体力和近视等因素，也因为之前的职业关系，戴谐在现世一直在做的是计算统计供职，好歹也懂一些策略规划，因此被安排进了计委任职，任务是掌握各个组所需的物资和工具，分配到各组，检查并记录这些资源的使用和消耗情况。由于来到这个世界后，所有现代化的工具和物资都是用一点少一点，为了杜绝可能的浪费，对宝贵物资的管理是计委的主要工作。同时，计委也负责在当地采集、制造的原材料和成品的入库和再配给，工作相当的繁忙。
+Perhaps there really was such a thing as being guided by fate. Otherwise, how could he explain how an ordinary office worker like himself would participate in such a heaven-defying plan, even leaving without a proper suicide note? He had originally chosen to leave silently so as not to worry his family, but to have so lightly severed more than twenty years of family ties, upon reflection, he felt he was a bit heartless. But what was done was done, and there was no turning back. After personally witnessing that thin mirror-like surface vanish in a flash of white light, Dai Xie understood that from now on, everything in the present world had been abandoned. All that was left for himself and his comrades was one resolution—"to build a new world."
 
-　　此刻他的任务是用手持的PDA统计伐木的数量和被领取木材的去向，看到吴旷明狞笑着挥舞电锯，一棵棵大大小小的树轰然倒在泥水中，被惊吓的水鸟鼓噪着四散奔逃……完了，有这种杀器在手，中国的环境没有未来了，痛苦地闭上了眼睛。
+Due to his physical strength, myopia, and previous professional experience, Dai Xie had been doing calculation and statistics work in the modern world. He knew a thing or two about strategic planning, so he was assigned to the Planning Commission. His task was to manage the materials and tools needed by each group, distribute them, and inspect and record the use and consumption of these resources. Since coming to this world, every modern tool and material was one less when used. To prevent possible waste, the management of precious materials was the main job of the Planning Committee. At the same time, the committee was also responsible for the warehousing and redistribution of locally collected and manufactured raw materials and finished products. The work was quite busy.
 
-　　“树倒了，快闪啊！”吴旷明独特的尖叫让沉浸在环保思绪中的戴谐猛然惊醒，立马一招滚地葫芦，挪过了数尺，堪堪躲过轰然砸下的大树，才没险些成为了第一位烈士。
+At this moment, his task was to use a handheld PDA to count the number of felled trees and track the destination of the collected timber. He watched as Wu Kuangming brandished his chainsaw with a savage grin, and trees of all sizes crashed down into the muddy water, startling the water birds into a noisy, scattered flight... *It's over. With such a weapon in hand, there is no future for China's environment.* He closed his eyes in pain.
 
-　　“你妹！故意的吧！”戴谐一身泥水的暴跳如雷，冲着吴旷明吼着。
+"Timber! Get out of the way!" Wu Kuangming's unique shriek suddenly woke Dai Xie from his environmentalist reverie. He immediately did a rolling dive, moving several feet and narrowly avoiding the crashing tree, thus saving himself from becoming the first martyr.
 
-　　“哥哥我没妹妹……”吴旷明一脸无辜地看着小戴。两人之间的第一次过节就这样结下了。
+"Your sister! Did you do that on purpose?!" Dai Xie, covered in mud, jumped up in a rage and roared at Wu Kuangming.
 
-　　卓天敏坚决的守株待兔，终于优先得到了木材，随后建筑组就在靠近海边的地方找个地基结实的地方，开始挖坑了。田九九的专业是排水专业，于是给穿越众们修厕所就成了他的第一个业务。厕所是保证营地卫生的重要设施，其重要性还排在食堂之前。
+"Brother, I don't have a sister..." Wu Kuangming looked at Little Dai with an innocent expression. The first grudge between the two was thus formed.
 
-　　作为一名专业给排水工程人员，要田九九造间简易厕所当然不是什么复杂的事情，他掌握的各种方案应有尽有。可是眼下别说砖块水泥，连土坯砖都没有一块。唯一可用的就是少量的木材。
+***
 
-　　他原本拟定的厕所方案极其简单，直接在沙滩边的某个水岔上架起高架，上面铺上木板，木板间留下空位。四面再用枝叶一遮。排泄物直接入海，即简单又方便。某些环保人士和农业组的极力反对，环保人士是指责其污染环境，农业组则还指望着靠这些玩意去当肥料——他可算是了解到[吴南海][y009]的抠门了——他说起这些东西来的狂热神情就好像在说什么金银财宝。
+Zhuo Tianmin resolutely waited by the tree for the rabbit, and finally got priority access to the timber. Then, the construction group found a place with a solid foundation near the sea and began to dig pits. Tian Jiujiu's specialty was drainage, so building toilets for the transmigrators became his first job. The latrine was an important facility to ensure the sanitation of the camp, its importance even ranked before the cafeteria.
 
-　　显然执委会被他的慷慨陈词忽悠了，厕所方案便重新做了修订，改为挖坑式，如果仅仅是挖坑式厕所也是很简单的，坑上面架木板，和他的水上厕所大致相同，但是这类坑式厕所一般不考虑粪便利用问题，差不多满了直接洒上石灰填埋就完事。如果要粪便利用，挖坑厕所就只能用掏粪工了。
+As a professional water supply and drainage engineer, building a simple toilet was certainly not a complicated matter for Tian Jiujiu. He had all kinds of plans at his disposal. But right now, let alone bricks and cement, there wasn't even a single adobe brick. The only thing available was a small amount of wood.
 
-　　“既然农业组这么喜欢这玩意，就让他们来掏粪好了。”田九九愤愤道——挖坑式厕所的最大问题是土方工作量大。
+His original plan for the toilet was extremely simple: build a high platform over a water channel near the beach, lay wooden planks on it with gaps in between, and then cover the four sides with branches and leaves. The excrement would go directly into the sea, which was simple and convenient. Some environmentalists and the agriculture group strongly opposed this. The environmentalists accused it of polluting the environment, while the agriculture group was still counting on using this stuff as fertilizer. He had finally come to understand how stingy [Wu Nanhai][y009] was—the fervent expression on his face when he talked about this stuff was as if he were talking about gold and silver treasures.
 
-　　要供近600人使用的厕所，按每50－60人有1个蹲位的考虑，男厕共设10个蹲位，小便槽1条；另设女厕2个蹲位。坑为狭长形，坑底呈坡度，便于粪尿下流至集粪坑内。集粪坑设在厕所外面，上安木盖，便于清理掏粪。正常情况下，坑底和四壁应该用水泥抹平，至少应该用砖砌，否则容易造成污物渗入地下水造成污染，但是此时没这个条件，只能采用夯土机尽量夯实，好在这里的地下水本身就是含盐卤的无法利用，污染些也无所谓。
+Apparently, the Executive Committee was swayed by his impassioned speech, and the toilet plan was revised to a pit-style one. If it were just a pit latrine, it would also be very simple. Lay wooden planks over the pit, similar to his over-water toilet. But this type of pit latrine generally does not consider the use of feces; when it is almost full, you just sprinkle lime on it and fill it in. If you want to use the feces, you have to use a night soil collector for the pit latrine.
 
-　　在动用了挖土机和几个“基本劳力”小组之后，坑总算都挖好了，没有砖头，就用现成的树干做坑边，再用土埋实。没有蹲坑用的木板，就用打筒削下来的枝条用藤条捆成筏子代替。四面架起屋架子，墙壁没砖，还是土办法，先用树棍一根一根的稀疏的直立埋好，再用从红树林里拉来大量的藤条反复缠绕在这些树棍之间，然后再再当中插上许多小的枝条，最后用树叶杂草拌和粘泥，堆在这藤土的墙上，里外用泥刀抹平——除了表面疙疙瘩瘩之外，看上去倒也整齐——田九九可知道，这墙壁里的材料都没干燥过，太阳多晒点日子立马要出问题。
+"Since the agriculture group likes this stuff so much, let them be the ones to collect the night soil," Tian Jiujiu said angrily—the biggest problem with pit latrines was the large amount of earthwork.
+
+To build a toilet for nearly 600 people, considering one squatting position for every 50-60 people, the men's toilet would have 10 squatting positions and 1 urinal trough; another 2 squatting positions would be set up for the women's toilet. The pit was long and narrow, with a sloped bottom to facilitate the flow of feces and urine into a collection pit. The collection pit was located outside the toilet, with a wooden cover on top for easy cleaning and collection. Under normal circumstances, the bottom and four walls of the pit should be smoothed with cement, or at least lined with bricks, otherwise it would easily cause waste to seep into the groundwater and cause pollution. But at this time, they didn't have the conditions, so they could only use a rammer to compact the earth as much as possible. Fortunately, the groundwater here was already brackish and unusable, so a little pollution didn't matter.
+
+After using an excavator and several "basic labor" groups, the pits were finally dug. Without bricks, they used tree trunks as the pit edges and buried them with earth. Without wooden planks for the squatting positions, they used branches trimmed from the logs, tied together with vines to form rafts instead. A frame was erected on all four sides. There were no bricks for the walls, so they used an old method: first, they sparsely planted sticks upright, then they repeatedly wrapped a large number of vines brought from the mangrove forest around these sticks, and then inserted many small branches in between. Finally, they mixed leaves and weeds with sticky mud and piled it on this wattle-and-daub wall, smoothing it inside and out with a trowel. Except for the bumpy surface, it looked quite neat. But Tian Jiujiu knew that the materials in these walls had not been dried, and they would definitely have problems after a few days of sun exposure.
 [y009]: /characters/y009 "吴南海"
