--- a/_posts/2009-10-25-2-00800.md
+++ b/_posts/2009-10-25-2-00800.md
@@ -1,97 +1,92 @@
 ---
 layout: post
-title: 第八节 剪彩
+title: "Section 8: The Ribbon-Cutting"
 category: 2
 path: 2009-10-25-2-00800.md
 tag: [normal]
 ---
 
-　　屋顶他没什么好办法，即没有瓦片也没有木板，虽然申请了油布，却被计委打了回票。只好继续废物利用，把枝条编成的篱笆做覆盖物，刚一盖好顶真是郁郁葱葱，纯天然风格，看起来有点象国内那种自然原生态公园里的建筑。当然这纯天然材料的厕所基本没有防风雨能力，好在临高在中秋过后基本上就是旱季，雨水不多，台风也不光临了，凑合一下还行。最后一个步骤就是在门口分别刷上大大的男/女。
+He had no good solution for the roof. There were no tiles or wooden planks, and his request for tarpaulin had been rejected by the Planning Commission. He had to continue to make do with waste materials, using woven branches as a covering. As soon as the roof was finished, it was lush and green, with a purely natural style, looking a bit like a building in a domestic eco-park. Of course, this toilet made of purely natural materials had basically no ability to withstand wind and rain. Fortunately, Lingao was basically in its dry season after the Mid-Autumn Festival, with little rain and no typhoons, so it would have to do. The final step was to paint large "Male" and "Female" signs on the doors.
 
-　　建筑组的几个围绕着新落成的厕所转了好几个圈，心里真还有点激动——虽然它的结构如此的简陋，用途更是卑微，在21世纪恐怕连乞丐都懒得问津，却是穿越者亲手创造的第一所房屋，其意义是具有里程碑式的。连个浮捅码头也能竖纪念碑，这个建筑意义更大，起码也得竖一个“穿越登陆基地厕所旧址”的石碑才对。几个人正热烈的讨论着有关碑文该如何写得时候，梅晚提议：按理这种有关民生的建筑应该请个把执委来剪彩启用，才显得隆重正式。这个想法得到了田九九的热烈拥护——厕所毕竟是他的作品。于是梅晚致电执委会，要求举行厕所落成仪式——“事关民生，事关广大穿越群众的最根本利益，你们就看着办吧。”在海滩电话站上打完电话之后，梅晚想到既然要搞仪式，厕所里总不能搞得臭气熏天。这样对领导和媒体都不合适，便以“举行重大公共活动”为由，向代理军事组领导工作的何鸣申请派遣二名民兵进行“警戒”——他特意说明，不需要什么精兵强将，就一般民兵好了。何鸣是个老军人，听到有重大公共活动，还有执委会领导出席，立马把二名年轻的新兵调给了建筑工程组。于是叶孟言和魏爱文两位虽然并非军人出身，训练执勤最为积极的年轻人便接到了他的命令：
+The members of the construction group circled the newly completed latrine several times, feeling quite excited. Although its structure was so simple and its purpose so humble that in the 21st century probably not even a beggar would bother with it, it was the first building created by the hands of the transmigrators, and its significance was a milestone. If even a floating pontoon pier could have a monument, this building was even more significant. At the very least, a stone tablet inscribed with "Site of the Transmigrator Landing Base Latrine" should be erected. As several people were enthusiastically discussing how to write the inscription, Mei Wan proposed that, logically, a building related to the people's livelihood should have an Executive Committee member come to cut the ribbon for its inauguration to make it seem grand and formal. This idea received Tian Jiujiu's enthusiastic support—after all, the latrine was his creation. So, Mei Wan called the Executive Committee to request a latrine completion ceremony. "This concerns the people's livelihood, the most fundamental interests of the broad masses of transmigrators. You guys figure it out." After making the call at the beach telephone station, Mei Wan thought that since they were going to have a ceremony, the toilet couldn't be stinking to high heaven. That would be inappropriate for the leadership and the media. So, on the grounds of "holding a major public event," he applied to He Ming, the acting leader of the military group, to dispatch two militiamen for "guard duty." He specifically stated that he didn't need any elite soldiers, just ordinary militiamen. He Ming was an old soldier. Hearing that there was a major public event with Executive Committee leaders attending, he immediately assigned two young new recruits to the architectural engineering group. Thus, Ye Mengyan and Wei Aiwen, two young men who, although not from a military background, were the most active in training and on duty, received his order:
 
-　　“马上整理仪表，步枪上刺刀！跑步去红滩建筑工程组报到，执行特别警戒任务！”这道命令让两个拖着枪站了半天岗都淡出鸟来的年轻人精神振奋起来。赶紧洗脸整理一番就去报到了。
+"Tidy up your appearance immediately, fix bayonets on your rifles! Run to the Red Beach architectural engineering group to report for a special guard mission!" This order invigorated the two young men, who had been standing guard with their rifles for half a day until they were bored out of their minds. They quickly washed their faces, tidied up, and went to report.
 
-　　梅晚一看来了这两位生气勃勃的年轻人，还带着上了刺刀的SKS，英姿勃发，心中大喜，便要他们在厕所门前站岗，不许人进去拉屎撒尿。
+When Mei Wan saw these two energetic young men arrive with bayoneted SKS rifles, looking heroic, he was overjoyed. He had them stand guard in front of the latrine, not allowing anyone to go in to defecate or urinate.
 
-　　“没有执委会的命令，谁也不许进去！”他特意叮嘱了，“这是政治任务，要严肃对待！”
+"Without an order from the Executive Committee, no one is allowed in!" he specifically instructed. "This is a political task, and it must be taken seriously!"
 
-　　叶孟言和魏爱文面面相觑：给厕所站岗，这算那门子政治任务。
+Ye Mengyan and Wei Aiwen looked at each other: standing guard for a toilet, what kind of political task was this?
 
-　　“屁个政治任务。厕所不许拉屎撒尿，造这个干啥？”魏爱文有点恼火了。他在没穿之前一直和执委会的许多人打牌吹牛混得很熟，以为穿越之后会混个小职务，没想到第一天就是和一满脸青春痘的中学生一块站岗，这会更好，来给厕所站岗了！
+"What damn political task? If you can't shit or piss in a toilet, what's the point of building it?" Wei Aiwen was a little annoyed. Before transmigrating, he had often played cards and shot the breeze with many members of the Executive Committee and was quite familiar with them. He thought he would get a small position after transmigrating, but on the first day, he was standing guard with a middle school student with a face full of acne. Now it was even better, he was standing guard for a toilet!
 
-　　“一会要举办剪彩仪式，把厕所弄得臭哄哄的怎么行？”
+"There will be a ribbon-cutting ceremony later. How can we have the toilet stinking?"
 
-　　“靠，厕所不臭哄哄的难道还香喷喷的？”魏爱文把枪往旁边一杵，“执委会还管得了人拉屎撒尿？老子先去撒泡尿再说。”
+"Damn it, if a toilet doesn't stink, is it supposed to smell fragrant?" Wei Aiwen propped his gun to the side. "Can the Executive Committee even control when people shit and piss? I'm going to take a piss first."
 
-　　叶孟言一脸孔不耐烦，本来就有点不爽，这两个人还要吵架，便说：“吵毛啊，烦死了，做就是了。在那边也是站岗，这里也是站岗，管那么多！”
+Ye Mengyan looked impatient. He was already a bit annoyed, and now these two were arguing. He said, "What are you arguing about? It's so annoying. Just do it. It's standing guard over there, it's standing guard here. Why care so much!"
 
-　　“还是这位小同志有见地。”梅晚称赞着，又许愿晚上可以来工程组办公帐篷看“好孩子片”这才算把工作做通。
+"This little comrade has insight," Mei Wan praised, and then promised that they could come to the engineering group's office tent at night to watch "good-boy movies," which finally got the job done.
 
-　　厕所门前在为了派岗的事情磨叽，船尾楼上执委会也在为谁去出席互相推诿。露脸的事情人人都喜欢，但是这么个露脸法是在有点说不出来的别扭感。不去的话，似乎又对群众的利益过于漠视。最后[萧子山][y001]因为顶着个分管内务民生工作的头衔，推脱不过，只好去出席了。
+While they were haggling over the guard duty in front of the toilet, the Executive Committee on the sterncastle was also passing the buck on who should attend. Everyone likes to show their face, but showing their face in this way felt indescribably awkward. But not going seemed to show too much disregard for the interests of the masses. In the end, [Xiao Zishan][y001], because he held the title of being in charge of internal and civil affairs, couldn't refuse and had to attend.
 
-　　厕所门前早聚集了大批群众，看来这样的实事工程还是得民心的。[萧子山][y001]刚面露微笑的向他们挥了下手，就被一阵骂街声淹没了：
+A large crowd had already gathered in front of the toilet. It seemed that such a practical project was indeed popular with the people. Just as [Xiao Zishan][y001] smiled and waved at them, he was drowned out by a chorus of curses:
 
-　　“操行！装啥B呢，造个厕所不让人用！”
+"What the hell! What are you pretending for? You build a toilet and don't let people use it!"
 
-　　“这他妈的太官僚了吧。领导不来撒尿都不许了？”
+"Isn't this too damn bureaucratic? We can't even piss until the leader comes to take a leak?"
 
-　　“我要拉屎了……拜托快一点吧。”有人发出痛苦的哀号。
+"I need to take a shit... please hurry up," someone wailed in agony.
 
-　　……
+...
 
-　　[萧子山][y001]脸色变得很难看：厕所门前还有两个拿着SKS的卫兵站岗，刺刀雪亮——这算是哪一出啊。
+[Xiao Zishan][y001]'s face turned ugly. There were even two guards with SKS rifles and shining bayonets standing guard in front of the toilet—what kind of show was this?
 
-　　“萧委员，朝这里看！”丁丁举着个DV，正爬在特意调来的一辆挖泥车举起的车斗上，继续着他的连续报道，显然这个剪彩仪式很配他的胃口。丁丁一知道消息就和女友赶来了，在他看来，门口的卫兵，门前代充彩绸的藤条虽然不错，还是太过单调，缺少一些热闹的东西，特别是没有捧彩带的美女。于是十分钟后，测量回来的[李潇侣][y156]就莫名其妙的被套上一件不合身的旗袍和潘琳——丁丁的外国女朋友的大名——充当起了剪彩礼仪小姐。
+"Commissioner Xiao, look this way!" Ding Ding shouted, holding a DV camera. He was perched on the raised bucket of a specially dispatched excavator, continuing his live report. Apparently, this ribbon-cutting ceremony was very much to his taste. As soon as Ding Ding heard the news, he and his girlfriend rushed over. In his opinion, the guards at the door and the vine serving as a ribbon were nice, but it was too monotonous and lacked some excitement, especially the lack of beautiful women holding the ribbon. So, ten minutes later, [Li Xiaolü][y156], who had just returned from surveying, was inexplicably put into an ill-fitting cheongsam and, along with Pan Lin—the full name of Ding Ding's foreign girlfriend—became the ceremonial ribbon-cutting ladies.
 
-　　前凸后翘的潘琳穿着裹得紧紧的、衩开得高高的旗袍一出马，群众的焦点就变了，想拉屎撒尿的赶紧找个地方去方便，马上又回来占位置。要不是工程组力阻，有人都要爬到厕所的屋顶上去了。
+As soon as the curvaceous Pan Lin, wrapped in a tight, high-slit cheongsam, made her appearance, the focus of the crowd shifted. Those who needed to shit or piss quickly found a place to relieve themselves and then immediately returned to claim a spot. If not for the engineering group's efforts to stop them, some people would have climbed onto the roof of the toilet.
 
-　　在丁丁的策划里，潘琳除了要当礼仪小姐，还得充当报道记者——按他的规划，这些图像资料都要按合乎新闻宣传片的标准进行采集，以便作为日后重要的史料。
+In Ding Ding's plan, Pan Lin not only had to be a ceremonial lady but also a reporter. According to his plan, all this footage had to be collected according to the standards of a news propaganda film to serve as important historical material in the future.
 
-　　潘琳的汉语说得很溜，几乎没有外国人说汉语时平仄不分的毛病，她拿着采访机大家也比较愿意配合，丁丁自己拿DV，先拍了几个群众采访，群众纷纷表示这一工程的建成，极大的方便了他们的如厕，改善了基地的卫生状况。在采访中伐木组的绍宗充满感情地说道：“过去我们没有厕所，只能爬在晃悠悠的甲板上方便，即危险又污染环境。现在执委会想群众所想，急群众所急，及时修建了这一民心工程，我们广大穿越群众看在眼里，暖在心头。我代表广大群众感谢执委会，感谢工程组的全体同志们！”
+Pan Lin's Chinese was very fluent, with almost none of the tonal problems that foreigners often have when speaking Chinese. When she held the voice recorder, everyone was more willing to cooperate. Ding Ding himself held the DV camera and first filmed a few interviews with the crowd. The crowd expressed that the completion of this project greatly facilitated their toilet use and improved the sanitation of the base. During the interview, Shao Zong from the logging group said emotionally, "In the past, we had no toilets and could only relieve ourselves on the swaying deck, which was both dangerous and polluting. Now, the Executive Committee has thought of what the masses think, is anxious about what the masses are anxious about, and has timely built this popular project. We, the broad masses of transmigrators, see it in our eyes and feel it warm in our hearts. On behalf of the broad masses, I thank the Executive Committee and all the comrades of the engineering group!"
 
-　　正说得热烈，后面有人挤上：“靠，怎么到了这里还有人没经过我同意就要代表我！”
+As he was speaking enthusiastically, someone from behind squeezed through. "Damn it, how come even here there are people representing me without my consent!"
 
-　　“潘潘，刚才那句记得删掉。”丁丁吩咐着。
+"Panpan, remember to delete that last sentence," Ding Ding instructed.
 
-　　接着采访机转向了在门前的叶孟言，问其感想如何。小叶看着旗袍开领下雪白的深沟，头晕目眩，七颠八倒的也不知道说了些啥。丁丁想这段只好到时候重新配音了。现在他除了自己的女朋友之外，调派不到其他人手，举提示板的人没有。这么下去采访质量可提不高啊，得和执委会好好说说。
+Then the recorder turned to Ye Mengyan at the door, asking him for his thoughts. Little Ye stared at the deep, white cleavage visible under the collar of the cheongsam, feeling dizzy and light-headed, and didn't even know what he said. Ding Ding thought he would have to re-dub this part later. Right now, besides his girlfriend, he couldn't deploy any other personnel. There was no one to hold the cue cards. If this continued, the quality of the interviews would not improve. He had to have a good talk with the Executive Committee.
 
-　　总算剪彩仪式在一片和煦中结束了——虽然在剪断藤条的时候发生了些意外，这玩意的韧性十足，[萧子山][y001]费了半天劲才搞定。
+Finally, the ribbon-cutting ceremony ended in a harmonious atmosphere—although there was a small accident when cutting the vine. The thing was very tough, and [Xiao Zishan][y001] had a hard time getting it done.
 
-　　满头汗的[萧子山][y001]离开之前，忽然又想起了什么，他关照工程组，在厕所门口要竖一个大公告栏，用来张贴通知——对讲机可能没电，厕所总是要来的。
+Before leaving, covered in sweat, [Xiao Zishan][y001] suddenly remembered something. He instructed the engineering group to erect a large bulletin board at the entrance of the toilet for posting notices—the walkie-talkies might run out of battery, but everyone always had to come to the toilet.
 
-　　在靠近烽火台有一片被稀疏的林间空地上，营地卫生站已经在这里建设起来了。医疗部门有着很高的优先权，卫生所几乎是紧随着登陆指挥部就搭建好了，从船上取电的电线一接通，一条独立的供电线路就被拉到这里——虽然暂时还不要用电。
+***
 
-　　几个大型的帆布帐篷构成了门诊部——暂时重症病人还是会被送回到丰城轮去，船上条件毕竟要好的多。从帐篷的窗户望出去，特意保留下来没有砍伐的树木和旁边的溪水构成了美妙的风景——要给病人以良好的心情！
+In a clearing in a sparse wood near the beacon tower, the camp's health station had already been set up. The medical department had a very high priority. The health station was set up almost immediately after the landing command post. As soon as the power line from the ship was connected, an independent power supply line was pulled here—although there was no need for electricity for the time being.
 
-　　门诊部门口，一根竹竿已经被树立起来，卫生组长时袅仁升起了一面红十字旗。
+Several large canvas tents constituted the outpatient department—for now, seriously ill patients would still be sent back to the *Fengcheng*, where the conditions were much better. Looking out from the tent window, the trees that had been deliberately left uncut and the stream next to them formed a beautiful scenery—to give the patients a good mood!
 
-　　卫生组的其他人员则清点着将领取到的一部分日常需要的用品都清理出来，主要是手术器械（骨科和普外的）、敷料，若干糖水、盐水、还有一些常用药物。
+At the entrance of the outpatient department, a bamboo pole had been erected. The head of the health group, Shi Niaoren, raised a Red Cross flag.
 
-　　在清点的同时医院接诊了4名中暑、5个腹泻、2个上感病人。其中一个是晚上一时懒惰没用睡袋就爬到救生艇上睡觉的，现在发热起来。河马蹲在一边正给这倒霉蛋量体温。
+The other members of the health group were sorting out some of the daily necessities they would receive, mainly surgical instruments (orthopedic and general surgery), dressings, some glucose and saline solutions, and some common drugs.
 
-　　“39.4度，还真是猛啊。”河马看了下体温计，“抬到船上医务室去。”
+While they were sorting, the hospital received 4 cases of heatstroke, 5 of diarrhea, and 2 of upper respiratory tract infections. One of them was a person who had been lazy at night and had slept on a lifeboat without a sleeping bag, and now had a fever. He Ma was squatting to one side, taking the unlucky guy's temperature.
 
-　　“上感？”张子怡填写着病历卡，她是另一位大夫杨宝贵的老婆，这位杨大夫虽然也属于卫生部门，却不在这里上班——他是个兽医，此时正忙着照顾甲板上动物集装箱里的大大小小的动物，包括他自己带来的五条狗。
+"39.4 degrees, that's quite high," He Ma said, looking at the thermometer. "Take him to the infirmary on the ship."
 
-　　“还好，就这么一个。天气帮忙啊。”河马收拾起医药箱，“我倒是担心的是这登陆之后的问题，昨晚我和时大夫也谈了，他是传染病方面的专家。海南有不少传染病，疟疾、霍乱都很常见，还有寄生虫的问题……”
+"Upper respiratory infection?" Zhang Ziyi was filling out the medical record card. She was the wife of another doctor, Yang Baogui. Although Dr. Yang also belonged to the health department, he did not work here—he was a veterinarian and was currently busy taking care of the large and small animals in the animal containers on the deck, including the five dogs he had brought himself.
 
-　　卫生组成员开了一个短会，讨论今后的工作的重点，会后时袅仁着给执委会写《疾病预防工作建议》：
+"Fortunately, it's just this one. The weather is helping," He Ma said, packing up his medical kit. "I'm more worried about the problems after landing. I talked with Dr. Shi last night. He is an expert in infectious diseases. Hainan has many infectious diseases. Malaria and cholera are very common, and there are also problems with parasites..."
 
-　　1、尽快发掘中医药人才（包括可能利用的本地人才），能够在节省现代药物的情况下确保穿越者一定的健康水平。
+The members of the health group held a short meeting to discuss the focus of their future work. After the meeting, Shi Niaoren wrote a "Proposal for Disease Prevention Work" for the Executive Committee:
 
-　　2、现代药物必须尽量节省。抗生素类要留给手术后的患者使用的。
-
-　　3、要作好人群的健康监控，出现传染病迹象立即隔离。
-
-　　4、穿越众不能随意将野兽和野果作为补充食物，此类食品应该首先送卫生所进行检疫。
-
-　　5、做好水净化工作。
-
-　　6、调查本地卫生状况，掌握第一手统计资料。
-
-　　7、制定具有强制力的卫生部门规章。
-
-　　8、加强营地卫生管理，生活垃圾必须深埋。
-[y001]: /characters/y001 "萧子山"
+1.  Discover traditional Chinese medicine talents as soon as possible (including possible use of local talents) to ensure a certain level of health for the transmigrators while saving modern drugs.
+2.  Modern drugs must be used as sparingly as possible. Antibiotics should be reserved for post-operative patients.
+3.  Do a good job of health monitoring of the population and immediately isolate any signs of infectious diseases.
+4.  Transmigrators cannot arbitrarily use wild animals and fruits as supplementary food. Such foods should first be sent to the health station for quarantine inspection.
+5.  Do a good job of water purification.
+6.  Investigate the local sanitation conditions and grasp first-hand statistical data.
+7.  Formulate mandatory health department regulations.
+8.  Strengthen camp sanitation management; domestic waste must be buried deep.
+[y001]: /characters/y001 "Xiao Zishan"
 [y156]: /characters/y156 "李潇侣"
