--- a/_posts/2009-10-26-2-00900.md
+++ b/_posts/2009-10-26-2-00900.md
@@ -1,89 +1,91 @@
 ---
 layout: post
-title: 第九节 营地
+title: "Section 9: The Camp"
 category: 2
 path: 2009-10-26-2-00900.md
 tag: [normal]
 ---
 
-　　他考虑着还要写些什么的时候，外面传来了吵吵声，原来农业组的[吴南海][y009]和时袅仁派去给厕所消毒的何平吵了起来，一路跑这里来要说法了。何平虽然穿越前是某国营大药厂的职工，实际上是做设备、仪器仪表维修工作的，并不懂药物药理之类的玩意，卫生组把他要来是因为其老婆赵艳梅是药厂霉菌种子实验室的技术员——时袅仁预备着以后要上制药厂项目，这赵艳梅先得留住了，留人老婆当然也得把先生给留着。
+As he was considering what else to write, he heard a commotion outside. It turned out that [Wu Nanhai][y009] from the agriculture group was arguing with He Ping, whom Shi Niaoren had sent to disinfect the toilets. They had brought their dispute all the way here to get a ruling. Although He Ping had been an employee of a large state-owned pharmaceutical factory before the transmigration, his job was actually in equipment and instrument maintenance; he didn't understand pharmacology. The health group had requested him because his wife, Zhao Yanmei, was a technician in the factory's mold culture laboratory. Shi Niaoren was preparing to start a pharmaceutical factory project in the future, and Zhao Yanmei had to be kept. To keep the wife, of course, they had to keep the husband.
 
-　　何平这人长方脸戴眼镜一副书生相，干脆就当了卫生组的文书，干干杂活跑跑腿什么的。怎么平白无故的和人吵起架来了？
+He Ping, with his rectangular face and glasses, looked like a scholar. He had simply become a clerk for the health group, doing odd jobs and running errands. Why would he suddenly get into an argument with someone?
 
-　　出去一看，[吴南海][y009]这胖子揪着何平，一脸愤懑的神情，何平则一脸委屈，手里还提着个装石灰的尼龙袋。
+When he went out to look, the portly [Wu Nanhai][y009] was grabbing He Ping, his face full of indignation. He Ping, on the other hand, looked aggrieved, still holding a nylon bag of lime in his hand.
 
-　　“是你让他去撒石灰的？”[吴南海][y009]看到头目出来了，便把火力集中到时袅仁身上。
+"Did you tell him to spread lime?" Seeing the leader emerge, [Wu Nanhai][y009] focused his fire on Shi Niaoren.
 
-　　“怎么？有问题吗？我们卫生组是在给厕所消毒。”
+"What? Is there a problem? Our health group is disinfecting the toilets."
 
-　　“你懂不懂化学？”[吴南海][y009]指着石灰，“粪便这类农家肥是氮性肥，不能与草木灰、石灰之类的碱性肥料混用。混用的结果就是中和失效。你这么派人大把的洒石灰，这厕所里的粪尿还有什么用？！”
+"Do you understand chemistry?" [Wu Nanhai][y009] pointed at the lime. "Manure is a nitrogenous fertilizer. It cannot be mixed with alkaline fertilizers like plant ash or lime. The result of mixing them is neutralization and loss of effectiveness. You send people to spread large amounts of lime like this, what use is the feces and urine in this toilet?!"
 
-　　时袅仁的脸色很不好看，他好歹也是留美博士，医学叫兽，在米国操过刀，在帝都防过疫，给一农大的本科生当面质问懂不懂化学，岂不是大大的没面子。不过转念一想，[吴南海][y009]身为农业口负责人也是执委之一，农业更是执委会准备大干快上的产业，将来许多后勤保障方面的事情怕还得靠农业部门——他自己是卫生口的负责人，双方负责人当面闹翻日后连个转圈的地步都没了。便稍稍定了定神，把火气压了下去。他倒真没想过这个肥效的问题，用石灰给厕所消毒，这是最最简单常见的消毒法了。处置传染性病人的排泄物时，用石灰消毒几乎是必经的手续。
+Shi Niaoren's face darkened. He was, after all, a US-educated PhD, a medical professor who had operated in the States and fought epidemics in the capital. To be questioned about his knowledge of chemistry by an undergraduate from an agricultural university was a great loss of face. But on second thought, [Wu Nanhai][y009], as the head of the agriculture department, was also a member of the Executive Committee, and agriculture was an industry the committee was preparing to develop rapidly. In the future, many logistical support matters might depend on the agriculture department. He himself was the head of the health department. If the two department heads had a public falling out, there would be no room for maneuver later. So, he calmed himself down and suppressed his anger. He really hadn't thought about the fertilizer effectiveness issue. Using lime to disinfect toilets was the simplest and most common disinfection method. When disposing of the excrement of infectious patients, disinfecting with lime was almost a mandatory procedure.
 
-　　“这是我们疏忽了。”时袅仁忙打招呼，好言好语的把[吴南海][y009]给哄走了，小何一脸不爽之色——执行领导的任务还被人说不是。
+"This was our oversight," Shi Niaoren said quickly, placating [Wu Nanhai][y009] with kind words until he left. Little He had a disgruntled look on his face—he was just carrying out a leader's orders and still got blamed.
 
-　　“不就是大粪么？给他多拉几泡不就是了！”
+"It's just shit, isn't it? Just have them take a few more dumps for him!"
 
-　　“我们也是在实践中学习嘛。”时大夫安抚自己的兵，“[吴南海][y009]搞农业需要靠肥料——什么什么庄稼一枝花之类。”看了一眼石灰袋，几乎没用掉多少。石灰还是从建筑工程部门搞来的——他舍不得那些漂白粉——还准备用来处理饮用水呢。
+"We are also learning through practice," Dr. Shi said, comforting his subordinate. "[Wu Nanhai][y009] needs fertilizer for agriculture—something about crops being like flowers." He glanced at the bag of lime; almost none of it had been used. The lime had been obtained from the construction engineering department—he was reluctant to use the bleaching powder, which he was saving to treat drinking water.
 
-　　石灰不能用，漂白粉又舍不得，粪便的无害化处理就得另外想辄。时袅仁主业是传染病学科，对防疫并不陌生，他知道一般排泄物的无害化处理有很多种，石灰、漂白粉之类起效快，如果没有的话，最简单的办法就是密封存储，但得有三级粪池——最差也得有粪缸……要不用点天然植物？他想起自己看过的书上说过，一些天然野生植物也可以代用。问题是他记不清到底是哪些植物了，而且他没学过中医，即使知道名字也未必认得出。
+Lime couldn't be used, and he was reluctant to use bleach. He had to think of another way for the harmless disposal of the feces. Shi Niaoren's main field was infectious diseases, so he was no stranger to epidemic prevention. He knew there were many ways to treat excrement harmlessly. Lime and bleach worked quickly. If those weren't available, the simplest method was sealed storage, but that required a three-stage septic tank—or at the very least, a manure vat... What about using some natural plants? He remembered reading in a book that some natural wild plants could be used as substitutes. The problem was, he couldn't remember which plants, and since he hadn't studied traditional Chinese medicine, he might not recognize them even if he knew the names.
 
-　　正想着是不是该打个报告询问下哪里有中医药方面的人才，这边田九九又进来问卫生组到底打算采用哪种水处理手段，他们好尽快拿出供水方案来施工。
+Just as he was thinking about whether he should write a report to inquire about any talents in traditional Chinese medicine, Tian Jiujiu came in again to ask which water treatment method the health group planned to adopt, so they could quickly come up with a water supply plan and start construction.
 
-　　“这还真是一个出一个进啊。”时袅仁喃喃自语。
+"It's really one in, one out," Shi Niaoren muttered to himself.
 
-　　“什么？”田九九一连疑惑。
+"What?" Tian Jiujiu looked puzzled.
 
-　　“没什么，我这就来工地。”
+"Nothing. I'm coming to the construction site now."
 
-　　供水系统是在卫生组的直接控制下进行的，博铺附近的浅表层地下水含盐比较高，不适合作为饮用水，深层水他们还没有条件开采。唯一可行的就是抽取文澜江的水了。
+The water supply system was under the direct control of the health group. The shallow groundwater near Bopu was relatively high in salt content and not suitable for drinking. They did not yet have the conditions to exploit deep groundwater. The only feasible option was to draw water from the Wenlan River.
 
-　　作为供水来说，最为理想的是泉水或者深层地下水，象文澜江这样的河流，流量较大，有比较好的自净能力，也属可以利用的水源，但是此地系河流三角洲地区，水质一般都有较大的污染，水处理要复杂一些。
+For water supply, the ideal sources are spring water or deep groundwater. A river like the Wenlan, with a relatively large flow and good self-purification capacity, was also a usable water source. However, this was a river delta area, where the water quality is generally more polluted, and water treatment would be more complicated.
 
-　　时袅仁测试了水深和流量，又从水面下50厘米处提取了250ml水样，他手里没有检测设备，只好用最简单的目测鼻闻法。
+Shi Niaoren tested the water depth and flow rate, and took a 250ml water sample from 50 cm below the surface. He had no testing equipment on hand, so he had to rely on the simplest method of visual inspection and smelling.
 
-　　看下来的结果，他连连摇头。原以为以17世纪的污染程度来说，河水应该是非常清洁的，事实是水里的泥沙虽然少，藻类却很多。说明水体内有机物含量过于丰富，这在现代时空当然没什么奇怪的——都是化肥闹得，但是大明是没有化肥的，有机质含量这么高只表明河水的中上游是发达的农业区或者居民点。
+The results made him shake his head repeatedly. He had originally thought that given the level of pollution in the 17th century, the river water should be very clean. The truth was, although there was little sediment in the water, there was a lot of algae. This indicated that the organic matter content in the water body was too high. This was not surprising in the modern era—it was all caused by chemical fertilizers. But there were no chemical fertilizers in the Ming Dynasty. Such a high organic content only indicated that the middle and upper reaches of the river were developed agricultural areas or residential areas.
 
-　　当然，这水要利用也不是不可以，按时袅仁的观察，这水按现代标准好歹也有Ⅲ类水的标准——现代有些城市自来水厂的取水口都达不到这个标准。
+Of course, it wasn't impossible to use this water. According to Shi Niaoren's observation, this water could at least meet the standard for Class III water by modern standards—some modern city waterworks' intake points didn't even meet this standard.
 
-　　这样的水质要作为饮用水就必需使用一套相当复杂的沉淀、过滤、消毒流程，不管采取哪一种供水模式，都需要沉淀池、过滤井、消毒池、水渠……对建筑材料奇缺的工程组来说岂不是天方夜谭。
+To use such water for drinking would require a rather complex process of sedimentation, filtration, and disinfection. No matter which water supply model was adopted, it would require sedimentation tanks, filtration wells, disinfection pools, water channels... For the engineering group, which was short of building materials, this was simply a fantasy.
 
-　　再考虑到古代糟糕的传染病形势，水体里含有霍乱伤寒病菌的可能性很大。时袅仁考虑再三，认为在没有条件建立起水处理设施之前，还是不要利用河水为好。
+Considering the terrible infectious disease situation in ancient times, the possibility of cholera and typhoid bacteria in the water was very high. After careful consideration, Shi Niaoren believed that it was better not to use the river water before they had the conditions to build water treatment facilities.
 
-　　“还是从船上往岸上送淡水吧。”他叹了口气，直接去[马千瞩][y005]汇报去了。
+"Let's just transport fresh water from the ship to the shore," he sighed and went directly to report to [Ma Qianzhu][y005].
 
-　　[马千瞩][y005]对船上的淡水问题如何解决不大了解，就打了个电话问蒙德。
+[Ma Qianzhu][y005] didn't know much about how to solve the fresh water problem on the ship, so he called Meng De to ask.
 
-　　“船上的水倒是有，就是顶不了多久。”蒙德解释说：一般的船体设计，至少都有两个淡水舱。一个贮存饮用水，是进港后通岸接驳过来的淡水；一个贮存日用水，是从主机冷却水里经冷凝而来的蒸馏水。这种经海水淡化而来的软水，平常用来作卫生盥洗用，一般不喝。有时饮用水不够用，也可以饮用。
+"There is water on the ship, but it won't last long," Meng De explained. A typical ship design has at least two freshwater tanks. One stores drinking water, which is fresh water connected from the shore when in port; the other stores daily-use water, which is distilled water condensed from the main engine's cooling water. This soft water, desalinated from seawater, is usually used for washing and is generally not drunk. Sometimes, when drinking water is insufficient, it can also be drunk.
 
-　　丰城轮因为是作为远洋轮设计的，它的淡水舱有4个，储水量相当大。但是原来的设计是供应四五十个船员的，现在有近六百号人，稍微有点吃力。辅机运转时候新产生的蒸馏水数量有限，也没法大规模长期供应。
+Because the *Fengcheng* was designed as an ocean-going vessel, its freshwater tanks were quite large, with a considerable storage capacity. But the original design was to supply a crew of forty to fifty people. Now there were nearly six hundred people, which was a bit of a strain. The amount of new distilled water produced when the auxiliary engine was running was limited and could not be supplied on a large scale for a long time.
 
-　　“用辅机供淡水！”[马千瞩][y005]听了他的汇报，眉头皱成个疙瘩，“这是在拿柴油换水啊！”他有点惋惜，“河里可不淌柴油啊。”
+"Using the auxiliary engine to supply fresh water!" [Ma Qianzhu][y005]'s brow furrowed into a knot when he heard the report. "This is exchanging diesel for water!" he said with some regret. "The river doesn't flow with diesel."
 
-　　时袅仁知道他心疼船上的油料，但他知道临高这地方，历史上霍乱、伤寒、副伤寒之类的肠道传染病流行十分广泛，直到20世纪七八十年代，霍乱伤寒还曾经小规模爆发。虽说眼下穿越众拜现代医学的所赐注射了疫苗，但是难保一定会没事——就算没得传染病，急性肠炎爆发也够他们受的。
+Shi Niaoren knew he was pained about the ship's fuel, but he also knew that in Lingao, intestinal infectious diseases like cholera, typhoid, and paratyphoid were historically widespread. Even in the 1970s and 80s, there were small-scale outbreaks of cholera and typhoid. Although the transmigrators had been vaccinated thanks to modern medicine, there was no guarantee that they would be fine. Even if they didn't get an infectious disease, an outbreak of acute gastroenteritis would be enough to make them suffer.
 
-　　在痛陈利弊之后，[马千瞩][y005]只好接受了这个建议。为了尽可能节约用水，指挥部商讨之后决定：在岸上设立集中供水站，用浮桶线路铺设输水软管，将船上的淡水引到生活区里的一个2吨容量的不锈钢水塔里——仅供饮用和盥洗。
+After a thorough explanation of the pros and cons, [Ma Qianzhu][y005] had to accept the suggestion. To save water as much as possible, the command post discussed and decided: to set up a centralized water supply station on shore, use a floating barrel line to lay a flexible water pipe, and lead the fresh water from the ship to a 2-ton stainless steel water tower in the living area—for drinking and washing up only.
 
-　　“至于洗澡什么的，暂时就先克服克服吧。”[马千瞩][y005]知道这个淡水限量供应政策肯定会给他招来无数的咒骂，但也只好这样了。他坐下起草了个文件，由OA发送出去。“建筑材料”他在自己的记事本上写了一笔，今天的好多事情都被这个建筑材料限死了，晚上开会的时候一定要设法解决。
+"As for bathing and such, we'll just have to make do for now," [Ma Qianzhu][y005] knew that this limited water supply policy would surely bring him countless curses, but he had no choice. He sat down and drafted a document, which was sent out via the OA system. "Building materials," he wrote in his notebook. Many things today had been limited by this building material shortage. He had to find a way to solve it at the meeting tonight.
 
-　　暮色渐渐浓重，D日的白天即将过去。随着步话机里传来“收工”的命令，在外围工地干了一天活的穿越者们三三两两的向营地汇拢过来。
+***
 
-　　伐木组的人，一边说话一边从红树林返回。肩上扛着工具，虽然身体疲倦不堪，但是每个人的心里都有种热烈的情绪，彼此间的感情似乎也增进了不少。
+The twilight gradually deepened, and the first day of D-Day was about to pass. With the command of "knock off" coming from the walkie-talkie, the transmigrators who had been working on the outer construction sites all day returned to the camp in small groups.
 
-　　潮水正在退去，海水冲刷着海湾内的大大小小的岩石。远远望去，西边的天际显出临高角的轮廓。血红的夕阳，在散乱的云朵霞片中徐徐下沉。博铺湾的天光海色浑然相融，熠熠生辉。海水，如同被大火烧着了一般，变得一片金红。
+The members of the logging group were talking as they returned from the mangrove forest. They carried their tools on their shoulders. Although their bodies were exhausted, there was a fervent emotion in everyone's heart, and the feelings between them seemed to have deepened a lot.
 
-　　穿越者的船队，依次停泊在海湾里，黝黑的船影被霞光镶嵌上一道光芒四射的金边，这些普通的不能再普通的货船、渔船，此时此刻在他们看来，如同帕斯卡海湾内的帝国舰队一般宏伟。
+The tide was receding, and the seawater washed over the large and small rocks in the bay. Looking into the distance, the silhouette of Lingao Cape appeared against the western sky. The blood-red setting sun slowly sank among the scattered clouds. The light of the sky and the color of the sea in Bopu Bay merged into one, shining brightly. The seawater, as if set on fire, turned a golden red.
 
-　　这壮美的景色让他们如痴如醉，莫名的激动让他们沉默无语，也不仅是他们，那些从其他外围工地上回来的穿越众们也都放慢了脚步，望着这华美壮丽的一幕。
+The transmigrators' fleet was anchored in the bay in sequence. The dark silhouettes of the ships were edged with a radiant golden light by the afterglow. These ordinary cargo ships and fishing boats, at this moment, seemed as magnificent as the Imperial fleet in Pask's Gulf to them.
 
-　　“大家快走吧，天要黑了。”最后面的军事组人员一面招呼着他们一面参看有没有落单掉队的穿越者。按方案，他们要走在最后。确保没人在天黑后还在营地外面。
+This magnificent scenery intoxicated them. An inexplicable excitement left them speechless. And it wasn't just them; the transmigrators returning from other outer construction sites also slowed down their pace, gazing at this gorgeous and magnificent scene.
 
-　　“炮楼！”有人喊了一声，大家往营地的方向看去，那矗立着的烽火台四周已经围起了土围子，上面竖起了铁丝网，乍一看，还真像老片子里的日本炮楼。
+"Let's go, everyone, it's getting dark," the military group personnel at the rear called out to them while checking to see if any transmigrators had been left behind. According to the plan, they were to walk at the very end, ensuring no one was still outside the camp after dark.
 
-　　整个营地经过一天的建设初具规模，以烽火台和巡检司的房屋为核心，整个营地呈不规则的五边形。外围开挖了一条宽5米深2米的壕沟，引来文澜河水注满，壕沟内测较外侧要筑高1米，上再布设铁丝网。铁丝网高2米，用木桩交叉固定着，埋得很结实，铁丝网的下部另外铺设蛇腹型铁丝网。在铁丝网之后，又用挖沟的泥土堆砌夯成一条长垒，上面挖了战壕。另外在长垒上修筑了六座8米高的木结构哨楼。
+"A blockhouse!" someone shouted. Everyone looked towards the camp. The towering beacon tower was now surrounded by an earthen wall, on top of which was a barbed wire fence. At first glance, it really looked like a Japanese blockhouse from an old movie.
 
-　　此时，沿着长垒都点着火把，把壕沟照得通亮。营地的大门敞开着。门楼上，二名哨兵手持步枪，站在一盏探照灯旁，门楼下挂着二盏电石灯，光线亮得刺眼。穿越者穿过大门，在门口的人力登记处扫描狗牌，接着在计委的堆货点交还工具和多余的资材。
+After a day of construction, the entire camp had begun to take shape. With the beacon tower and the inspection office buildings as its core, the entire camp was an irregular pentagon. A 5-meter wide, 2-meter deep moat was dug around the perimeter and filled with water from the Wenlan River. The inner bank of the moat was built 1 meter higher than the outer bank and was topped with a 2-meter high barbed wire fence, which was firmly fixed with crossed wooden stakes. Concertina wire was laid at the bottom of the barbed wire fence. Behind the barbed wire fence, the excavated earth was used to build a long rampart, on which a trench was dug. In addition, six 8-meter high wooden watchtowers were built on the long rampart.
 
-　　“柳正，对吧？”人力组的女办事员看了下电脑屏幕上显示出来的个人资料和照片，再和他的脸对比了一下，“你的营房编号B座14号。”
+At this time, torches were lit along the long rampart, illuminating the moat brightly. The main gate of the camp was open. On the gate tower, two sentries stood with rifles next to a searchlight. Below the gate tower hung two carbide lamps, their light dazzling. The transmigrators passed through the main gate, scanned their dog tags at the human resources registration point at the entrance, and then returned their tools and surplus materials at the Planning Commission's depot.
+
+"Liu Zheng, right?" the female clerk at the human resources group looked at the personal data and photo displayed on the computer screen, then compared it with his face. "Your barracks number is Building B, No. 14."
 [y005]: /characters/y005 "马千瞩"
 [y009]: /characters/y009 "吴南海"
