--- a/_posts/2009-10-3-1-03300.md
+++ b/_posts/2009-10-3-1-03300.md
@@ -1,144 +1,146 @@
 ---
 layout: post
-title: 第三十三节 救票
+title: "Section 33: The Rescue"
 category: 1
 path: 2009-10-3-1-03300.md
 tag: [normal]
 ---
 
-　　少女一出门王头儿便迎上来：
+As soon as the young woman left, Boss Wang hurried to meet her.
 
-　　“李当家的，这人说得话？”
+"Mistress Li, what about what that man said?"
 
-　　“真真假假。”李丝雅冷哼了一声，“有些话对证不出，只好任他说了。”
+"A mix of truth and lies," Li Siya snorted. "Some of it can't be verified, so we have to let him say what he wants for now."
 
-　　“给他吃点苦头，什么都说了。”
+"Let's give him a taste of pain. He'll spill everything."
 
-　　“花艇上不行，”李丝雅否决掉，“人多眼杂，地方又小，鬼哭狼嚎的不还马上露出风去。得换个地再拷问。”
+"Not on the flower boat," Li Siya vetoed. "Too many eyes and ears, and the space is too small. His screams would give us away immediately. We need to move him to another location for interrogation."
 
-　　“好，小的这就去办。”
+"Right, I'll arrange it at once."
 
-　　“口供出来之后的事情就随你们弟兄处置。想要留个退步的，别弄得他太惨；最好是处理干净。来个死无对证。”
+"After you get the confession, you and your brothers can do as you please with him. If you want to leave yourself an out, don't rough him up too badly. But it would be best to dispose of him cleanly. Leave no witnesses."
 
-　　“在下明白。”王头知道她动了杀人灭口的心了。
+"I understand," Boss Wang said, knowing she had decided to kill him to silence him.
 
-　　“消息送到老地方就是，这广州城我还要呆一段时间。”她招呼了一声“走吧。”暗处又出来个娉婷的身影，裹着黑色的大氅，两人跳上岸，迅速消失在黑暗中。
+"Send any news to the usual place. I'll be staying in Guangzhou for a while longer." She called out, "Let's go." Another graceful figure, wrapped in a black cloak, emerged from the shadows. The two of them leaped ashore and quickly disappeared into the darkness.
 
-　　良久，船舱里走出二个同伙：“王头儿，咱们？”
+After a long moment, two of Boss Wang's accomplices emerged from the cabin. "Boss Wang, what do we do?"
 
-　　“哼，到手的肥肉怎么能不吃。”王头儿为了表示轻蔑，往水里吐了一口痰，“她算老几，不过是替大当家的跑腿的货色。”
+"Hmph, how can we not eat the fat meat that's landed in our mouths?" Boss Wang spat into the water contemptuously. "Who does she think she is? Just an errand girl for the Big Boss."
 
-　　“挪窝的事……”
+"About moving him..."
 
-　　“挪个屁，这丫头懂什么。鬼哭狼嚎？把花艇撑出去，寻个荒水岔一靠慢慢问，来个大明十大酷刑也没人听得见。”
+"Move my ass! What does that girl know? Screams? We'll just pole the flower boat out to a deserted waterway, find a quiet spot, and take our time interrogating him. We could use all Ten Great Tortures of the Ming Dynasty and no one would hear a thing."
 
-　　“大明十大酷刑，有吗？”小喽罗一脸疑惑。
+"The Ten Great Tortures of the Ming Dynasty... is that a real thing?" a junior thug asked, looking puzzled.
 
-　　同伙知道他其实是心疼几个窝费，又眷恋这艇上的相好，打着肥水不流外人田的算盘。
+His accomplice knew that Boss Wang was actually just reluctant to spend money on a new safe house and was fond of his companion on the boat, planning to keep the prize for himself.
 
-　　不过这地方人多眼杂倒是真得。高举也不是省油的灯。还得多加些戒备才是。想了一下，吩咐几个手下：
+But it was true that this place had too many eyes and ears. And Gao Ju was no pushover. They needed to be more careful. After a moment's thought, he ordered his men:
 
-　　“人，还是藏在情胭的小艇上，马三和小赵去看着他。”
+"Keep the man hidden on Qingyan's small boat. Ma San and Little Zhao, you two watch him."
 
-　　接着又安排了二个暗哨，分别控制出入要道。其中一个疍家，使得一手好飞刀，二十步内百发百中，被他安排在离花艇最近的地方——真要有人来救票，双手飞刀至少可以毙伤一二个，有这段时间，足够马三把小艇划出去了。
+He then set up two more hidden sentries to control the access points. One was a Dan boatman, a master of throwing knives, accurate within twenty paces. He was placed closest to the flower boat. If anyone tried a rescue, his flying knives could take down at least one or two attackers, buying enough time for Ma San to row the small boat away.
 
-　　对头也可能从水上来，因此他把自己花得最大本钱——一个步弓手安排在花艇的后捎楼上——居高临下，周围一百步内的水面堤岸都能压住。
+An attack could also come from the water, so he placed his most expensive asset—an infantry archer—on the high rear deck of the flower boat. From that vantage point, he could command the water and banks within a hundred-pace radius.
 
-　　任你高老爷面子再大、钱再多，马步捕快也好，镖局也好，在百步穿杨的神箭手面前都是渣！王头儿得意的想，这个步弓手是逃军，但有一手好箭法，准头精，射得快。他很花了一些钱才通过城里的游手专门雇请到的。
+*No matter how much face or money Master Gao has, his constables and escort guards are nothing but trash in front of a master archer who can shoot a willow leaf at a hundred paces!* Boss Wang thought with satisfaction. The archer was a deserter from the army, but he was a superb shot—accurate and fast. He had spent a good sum of money to hire him through the city's underworld connections.
 
-　　银子，王头儿一点不吝惜的——最后还不是赎票的付账，自己何必替人省银子。三个暗哨加二个看票的，每人都先给了十两，还许了得了赎金之后再每人分五十两。便是那花艇上抗叉（妓院赌场的保镖）的废物，他也给了五两。一群鸡鸣狗盗之徒顿时都是精气神十足，摩拳擦掌。
+Boss Wang didn't spare any expense—the ransom would cover it all in the end, so why should he save money for others? The three sentries and two guards watching the hostage were each given ten taels of silver upfront, with a promise of fifty more each after the ransom was paid. Even the useless bouncers on the flower boat got five taels. The gang of rogues was instantly filled with vigor, rubbing their hands in anticipation.
 
-　　正分派着，派去和监视濠畔街眼线的舌人（联络员）回来了。这是王头定下的制度：每天分早晚一日两报，汇报高家和海商宅子的动静。
+As he was giving out orders, the liaison sent to communicate with the lookouts on Haopan Street returned. This was a system Boss Wang had established: two reports a day, one in the morning and one in the evening, on the movements at the Gao residence and the sea merchants' house.
 
-　　“有什么动静？”
+"Any movement?"
 
-　　“没异常，高家忙忙碌碌的，进进出出的人不少，但是没人去官府或镖局。打听过了，他们要接个京城里的贵客。”
+"Nothing unusual. The Gao residence is busy, lots of people coming and going, but no one has gone to the authorities or any escort agencies. We asked around; they're preparing to receive a distinguished guest from the capital."
 
-　　“澳洲海商那边呢？”
+"What about the Australian sea merchants?"
 
-　　“从外面看也没有动静。不过……”
+"No movement from the outside. But..."
 
-　　“什么？”
+"What?"
 
-　　“他们今天放了大半天的炮仗！”
+"They were setting off firecrackers for most of the day!"
 
-　　“已经查明，”冉耀再次站在了被竖起来的大方桌前，只不过石灰饼子换成了一支真正的粉笔，“我们敬爱的[文主席][y002]被藏在白鹅潭和字堤第四艘花艇上，字号是‘绚珠’。”
+***
 
-　　以北炜为首的几个人正静声默气地看着冉耀和桌子。他们身后的一张大画桌上，丢着好些个正在充电的对讲机充电器，一台19寸液晶显示器正不间断的播放着摄像头拍摄出来的近10个画面，桌子地下堆满了机箱、蓄电池组和乱做一团的电线。空气被加热的十分燥热，正轮班负责看摄像头的[萧子山][y001]只穿着件老头汗衫，还是满头冒汗。
+"It's confirmed," Ran Yao announced, once again standing before the large, upright square table. This time, however, the chalk stick was a real one. "Our beloved [Chairman Wen][y002] is being held on the fourth flower boat from the Hezi Embankment at White Goose Pool. The boat's name is 'Xuanzhu'."
 
-　　一张被放大了打印出来的数码照片被双面胶粘在了紫檀木的桌面上。这种花艇是宽平首，船艄翘起很高，后设大橹，船头设二枝小橹，便于在狭窄的水域内进退。船上雕梁画栋，装饰得十分漂亮。
+Several men, led by Bei Wei, watched Ran Yao and the table in silence. On a large drawing table behind them lay several walkie-talkie chargers, their lights blinking. A 19-inch LCD monitor displayed nearly ten different camera feeds. Under the table was a heap of computer cases, battery packs, and a tangled mess of wires. The air was hot and stuffy. [Xiao Zishan][y001], on duty monitoring the cameras, was wearing only an old-fashioned undershirt and was still sweating profusely.
 
-　　花艇不分大小都有头舱、中舱和尾梢三个部分，中舱最大，大约占到船只的一半大小，四面垂帘，私秘性很强。根据推测[文总][y002]很可能就被藏在这里。
+An enlarged, printed digital photo was taped to the rosewood tabletop. It showed a flower boat with a wide, flat bow and a high,翹 stern, with a large oar at the back and two smaller ones at the front for maneuvering in narrow waters. The boat was beautifully decorated with carved beams and painted rafters.
 
-　　艇上一共有五个人常住：老鸨、两个妓女、打杂的婆子和扛叉的。
+All flower boats, regardless of size, had a bow cabin, a central cabin, and a stern section. The central cabin was the largest, taking up about half the boat's length, and was draped with curtains on all sides for privacy. They presumed [Director Wen][y002] was most likely being held there.
 
-　　“根据起威镖局侦察到的情况，这艘花艇从上个月二十就挂出谢客的牌子来，称有人包船，最近十几天，有几个经常出入，这些人虽然能说白话，却不是本地人，有人听到他们彼此说话是闽南口音。
+The boat had five permanent residents: the madam, two prostitutes, a serving woman, and a bouncer.
 
-　　“除了一个姓王的，其他人都不在本艇上过夜。这个王姓犯罪嫌疑人每天一早就出门，临近傍晚才归。
+"According to the intelligence gathered by the Qiwei Escort Agency, this flower boat has had a 'Not Receiving Guests' sign up since the twentieth of last month, claiming to be chartered. Over the last ten days or so, several men have been seen coming and going frequently. Although these men can speak Cantonese, they are not locals. Someone overheard them speaking to each other in a Southern Fujianese dialect.
 
-　　“三天前，也就是[文总][y002]失踪的那天开始，这些人都不见了，包船的牌子却没取下，每日所送的食物、菜蔬也不见少。昨天，有人看到艇上的老举（妓女）拿着一只闪闪发亮的小物件在炫耀。通过镖师描述，我们认为那应该是一个指甲钳。”
+"Except for one man surnamed Wang, none of them spend the night on the boat. This suspect, Wang, leaves early every morning and returns around dusk.
 
-　　“指甲钳？”
+"Three days ago, the day [Director Wen][y002] disappeared, these men vanished, but the 'chartered' sign was not taken down, and the daily delivery of food and vegetables did not decrease. Yesterday, one of the prostitutes on the boat was seen showing off a small, shiny object. From the escort agency's description, we believe it was a nail clipper."
 
-　　“对，一只五羊塑料贴片的小号指甲钳。在失物清单里，它应该是……[萧子山][y001]的东西。”
+"A nail clipper?"
 
-　　“还有一点可以作为证据。”他新贴上了一张数码照片，“根据我们对最近二天在出现在该艇周边的人物进行的逐一拍摄辨认，这个人就是我们事发当日在濠畔街茶馆拍摄到的可疑分子。”
+"Yes, a small one with a 'Five Rams' plastic cover. On the list of missing items, it should be... [Xiao Zishan][y001]'s."
 
-　　自从二天前起威镖局相当高效得通知[文总][y002]很有可能被藏在白鹅潭的花艇上之后，冉耀和北炜由孙常陪同，使用高举家女眷的轿子行列作为掩护，在白鹅潭进行了长时间的实地监视和拍摄。掌握了许多资料。经过侦察，他们认定起威镖局的消息是可靠的。
+"There is one more piece of evidence." He taped up another digital photo. "Based on our photographic identification of individuals appearing near the boat over the last two days, this man is the same suspicious individual we photographed in the teahouse on Haopan Street on the day of the incident."
 
-　　事不宜迟，当下决定马上动手。眼下赎票的信没来，情况稳定，匪人一旦换了地方，再查起来就难了。行动由冉耀带头，体育组的三个人外加一个林深河，起威镖局也出动几个镖师帮手。
+Two days prior, after the Qiwei Escort Agency had efficiently reported that [Director Wen][y002] was likely hidden on a flower boat in White Goose Pool, Ran Yao and Bei Wei, accompanied by Sun Chang and using the cover of Gao Ju's female family members' sedan chair procession, had conducted a long period of on-site surveillance and photography. They had gathered a great deal of information and, after their own reconnaissance, confirmed that the agency's intelligence was reliable.
 
-　　计划是由林深河负责用小口径步枪压制战场，体育组兵分两路突击，冉耀一组从堤上向花艇正面攻击，北炜则带另一个乘坐划艇从水上截断其逃跑的退路。一旦得手，全员由镖师驾车从堤上接应撤走。之所以不从水上撤退，是考虑到疍家水性精熟，又善操船，万一追来穿越众未必是他们的对手。
+There was no time to lose. They decided to act immediately. The ransom note hadn't arrived yet, the situation was stable, and if the bandits moved to a new location, it would be difficult to find them again. The operation would be led by Ran Yao, with the three members of the sports team plus Lin Shenhe. The Qiwei Escort Agency would also provide several men to assist.
 
-　　时间，选定五点三十动手，穿越众已经打听清楚白鹅潭的作息时间：这个季节里，花艇的生意要到六点过后才开始。在此之前行人不多；天光尚亮，视线不受阻碍。得手之后全员抢在城门关闭前撤退进城。匪首如在城外，反应过来已不可能入城，若在城内，这么短的时间内消息还传不进来——古代的通讯基本就是靠人两条腿走路传话。这方面穿越众有天然的优势。
+The plan was for Lin Shenhe to provide covering fire with a small-caliber rifle. The sports team would split into two assault groups: Ran Yao's group would attack the flower boat from the front on the embankment, while Bei Wei's group would take a small boat to cut off their escape route from the water. Once successful, the entire team would be extracted by the escort agency's carts from the embankment. They decided against a water retreat, considering the Dan people's expertise in swimming and boat handling; if pursued, the transmigrators might not have the upper hand.
 
-　　“天黑以后动手不是更好？我们有夜视镜，他们就是睁眼瞎了。”
+The time was set for 5:30 PM. The transmigrators had learned the daily routine of White Goose Pool: during this season, the flower boats' business didn't start until after 6:00 PM. Before that, there were few pedestrians, and the light was still good, ensuring clear visibility. After the operation, the entire team would withdraw into the city before the gates closed. If the bandit leader was outside the city, he wouldn't be able to get back in time to react. If he was inside, the news wouldn't reach him quickly enough—in this era, communication relied on people running. The transmigrators had a natural advantage in this regard.
 
-　　“天黑以后城门就关了，我们人生地不熟的在城外和他们周旋，未必能占上风。明朝的夜盲症不一定有想像得那样多。”
+"Wouldn't it be better to act after dark? We have night vision goggles; they'd be blind."
 
-　　计划停当，大家分头准备。每人都穿了防刺背心，另防落水备有应急充气救生带。突击组的四个人钢盔、护目镜、作战靴、防刺手套，都是防护到了牙齿的级别。为遮人耳目，外罩一件带兜帽的布大氅。
+"The city gates close after dark. We'd be fighting them in unfamiliar territory outside the city, and we might not have the advantage. Night blindness in the Ming Dynasty might not be as common as we imagine."
 
-　　[王工][y003]留守本宅，配五连发一枝。[萧子山][y001]则负责和接应的镖师在一起，作为通讯员掌握对讲机。所有人都配一台对讲机，随时联系。
+With the plan settled, everyone began their preparations. They all wore anti-stab vests and were equipped with emergency inflatable life belts in case they fell into the water. The four members of the assault team were protected from head to toe with steel helmets, goggles, combat boots, and anti-stab gloves. To avoid attracting attention, they wore hooded cloth cloaks over their gear.
 
-　　吃过午饭，林深河和[萧子山][y001]说了几句，[萧子山][y001]点点头出去了。他自己提着那支峨嵋牌小口径步枪，在桌子上做了一回分解。这是一种相当优秀的国产运动步枪，这款是其中的EM751型自选式步枪，5.6毫米口径，配用4倍光瞄的话，他有把握击中200米之内的人体。
+[Engineer Wang][y003] would remain at the residence, armed with a five-shotgun. [Xiao Zishan][y001] would be with the escort agency's support team, acting as the communicator with a walkie-talkie. Everyone was equipped with a walkie-talkie for constant contact.
 
-　　不过他在国外玩过得枪虽多，对这款步枪却没有手感——要确保能打得准，就得做一些试射。
+After lunch, Lin Shenhe had a few words with [Xiao Zishan][y001], who nodded and went out. Lin himself took his Emei brand small-caliber rifle and disassembled it on a table. It was an excellent domestic sports rifle, model EM751, with a 5.6mm caliber. With a 4x scope, he was confident he could hit a human target at 200 meters.
 
-　　枪虽然旧，但保养的很好。林深河边分解边擦拭，正干着活，北炜从前面转了过来，看他在擦枪，本来想说得话又咽了下去，只在一旁默默的看。
+However, while he had played with many guns abroad, he wasn't familiar with this particular rifle. To ensure accuracy, he needed to do some test shots.
 
-　　直到他重新把枪组装完毕，才开了口：
+The gun was old but well-maintained. Lin Shenhe cleaned it as he disassembled it. Bei Wei came over from the front yard and saw him cleaning the gun. He swallowed the words he was about to say and just watched silently.
 
-　　“小林啊，”他吞吞吐吐的，似乎不知道如何开口，“你当狙击手这事……”
+Only after Lin had reassembled the rifle did Bei Wei speak.
 
-　　“怎么，怕我干不了？”林深河毫不以为意，把枪举起来，连着做了几个抵肩动作。
+"Little Lin," he began hesitantly, as if unsure how to start, "about you being the sniper..."
 
-　　“嗯。我知道你在美国打过的枪比我见过的还多，说起轻武器是一套一套的，”北炜迟疑了一下，“可你没当过兵，真刀真枪的上战场和你在靶场玩枪打靶不一样。”他吸了一口气，“按理说这狙击手该我自己来，突击组的人又不够。”
+"What, afraid I can't handle it?" Lin Shenhe replied nonchalantly, raising the rifle and practicing shouldering it a few times.
 
-　　“您放心好了。”林深河放下步枪，没再多解释，“陪我验枪去？”说着递给他一个望远镜。
+"Yes. I know you've fired more guns in America than I've ever seen, and you know your stuff when it comes to small arms," Bei Wei hesitated, "but you've never been a soldier. A real battlefield is different from shooting at targets on a range." He took a deep breath. "Logically, I should be the sniper, but we're short-handed in the assault team."
 
-　　北炜疑虑重重地接过了望远镜。试枪的靶场设在了院旁的备弄里，这里高墙深弄，封闭式的狭长环境是极理想的射击场地。[萧子山][y001]已经用皮尺在里面丈量出50米距离，还在墙上贴了一个纸靶。
+"Don't worry," Lin Shenhe said, lowering the rifle without further explanation. "Want to come with me to test the gun?" he asked, handing him a pair of binoculars.
 
-　　林深河在50米射击线上采取跪姿射击，调整好射击标尺，推弹上膛，关上射击保险。把右脚的脚跟垫在臀部下面，以保持稳定，右膝盖着地，调整着全身的射击姿态。
+Bei Wei took the binoculars, his face full of doubt. The test range was set up in a narrow service alley next to the courtyard. The high walls and enclosed space made it an ideal shooting gallery. [Xiao Zishan][y001] had already measured out a 50-meter distance with a tape measure and stuck a paper target on the wall.
 
-　　步枪上的4倍光学瞄准镜，把靶子的中心清清楚楚的映在眼前，此时一点风没有。院子里传来了凌乱的鞭炮和大炮仗的劈里啪啦声——这是掩盖他的试射。他自己几乎听不见，只感到脉搏在微微搏动，肌肉极其微小的颤动也能清楚的反应在瞄准镜里——黑色的靶心在随着肌肉的颤动有节奏的微微晃动。
+Lin Shenhe took a kneeling position at the 50-meter line, adjusted the sights, loaded a round, and engaged the safety. He tucked his right heel under his buttock for stability, right knee on the ground, and adjusted his posture.
 
-　　他屏住呼吸，在这呼吸静止的一秒里扣动了扳机。
+The 4x scope on the rifle brought the center of the target clearly into view. There was no wind. The chaotic crackle of firecrackers and larger explosives echoed from the courtyard—cover for his test shots. He could barely hear it, feeling only the slight beat of his pulse. The tiniest muscle tremor was clearly visible in the scope—the black bullseye swayed rhythmically with his body's vibrations.
 
-　　子弹的后座力比想像的小，小口径步枪又有专门的枪托缓冲垫，对习惯了各式各样轻武器的林深河同学来说几乎感觉不到。
+He held his breath and, in that still second, pulled the trigger.
 
-　　北炜举起了望远镜，看着摇了摇头。子弹的命中位置在7点至8点之间，虽然上了靶，还不到4环。
+The recoil was less than expected. The small-caliber rifle had a special stock buffer pad, and to someone like Lin Shenhe, accustomed to all sorts of firearms, it was almost unnoticeable.
 
-　　距离50米才打出4环来，距离200米恐怕子弹就不知道飞到哪里去了。
+Bei Wei raised the binoculars and shook his head. The bullet had hit between the 7 and 8 o'clock positions. It was on the target, but it was less than 4 rings.
 
-　　林深河没有动，也没有马上退壳，这是为了保持枪管的温度以利提高精度。重新上膛之后又打了一次，这次提高了2环，接着他又射了第三发，打在8环上。
+A 4-ring shot at 50 meters meant that at 200 meters, the bullet could end up anywhere.
 
-　　从第四发子弹开始，弹着点稳定起来，连着三发子弹几乎全打在8环上。他重新修订了下标尺，接下来的5次射击枪枪在10环里。
+Lin Shenhe didn't move or immediately eject the casing, wanting to maintain the barrel's temperature for better accuracy. After reloading, he fired again. This time, he improved by two rings. His third shot hit the 8-ring.
 
-　　“这样，应该是可以了吧。”林深河看着子弹盒里的弹药，这种5.6子弹不多了。本来他还想再打个10发。
+Starting with the fourth bullet, his shots stabilized. Three consecutive bullets landed almost perfectly in the 8-ring. He readjusted his sights, and the next five shots were all in the 10-ring.
 
-　　“枪法不错。”北炜简单的评价着，“战场上打的是人，你下得了手？”
+"This should be good enough, right?" Lin Shenhe said, looking at the remaining ammunition in the box. There weren't many of these 5.6mm rounds left. He had originally wanted to fire another ten shots.
 
-　　“为什么下不了？”他的脸上浮现起奇怪的笑容，“我经常打猎。”
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
+"Not bad marksmanship," Bei Wei commented simply. "But on the battlefield, you're shooting at people. Can you do it?"
+
+"Why couldn't I?" A strange smile appeared on his face. "I hunt often."
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
