--- a/_posts/2009-10-6-1-03600.md
+++ b/_posts/2009-10-6-1-03600.md
@@ -1,100 +1,100 @@
 ---
 layout: post
-title: 第三十六节 先知
+title: "Section 36: The Prophet"
 category: 1
 path: 2009-10-6-1-03600.md
 tag: [normal]
 ---
 
-　　当下应酬了几句，告辞出来。回到据点里。起威镖局的孙掌柜已经等候多时了。不等他拱手称谢，孙掌柜已然拱手道贺。[萧子山][y001]开支了一百两银子，作为谢礼。
+After exchanging a few pleasantries, [Xiao Zishan][y001] took his leave and returned to the outpost. Master Sun of the Qiwei Escort Agency had been waiting for some time. Before Xiao Zishan could offer his thanks, Master Sun was already bowing and offering his congratulations. [Xiao Zishan][y001] disbursed one hundred taels of silver as a reward.
 
-　　“几位掌柜真是文武全才！”孙掌柜接过银子笑得象一朵花似的，“好功夫，好犀利的火器！我那几个徒弟师侄回来都说，见过救票的，没见过这么救得干净利落的。”
+"You masters are truly talented in both literary and martial arts!" Master Sun beamed like a flower as he accepted the silver. "Such skill, and such sharp firearms! My apprentices and nephews all said when they returned that they've seen hostage rescues before, but never one so clean and decisive."
 
-　　“不是起威的诸位达官帮忙，我们这外乡之人，多半还在抓瞎呢。”
+"If it weren't for the help of all the masters from Qiwei, we strangers would likely still be fumbling in the dark."
 
-　　“哪里哪里，起威也是略尽绵薄之力。”孙掌柜随手将银子交给身后的小徒弟，“我有一言，请萧掌柜斟酌。”
+"Not at all, not at all. Qiwei only did what little we could." Master Sun casually handed the silver to a young apprentice behind him. "I have a word of advice, for Shopkeeper Xiao to consider."
 
-　　“好说。”
+"Please, speak freely."
 
-　　“这次救票虽然顺利，但是这里匪人已经来过，熟门熟路。要防着他们来报复。俗语说：有一日作贼的，无千日防贼的，老爷们这里财货众多，不可不小心从事。”
+"Although the rescue was successful, the bandits have been here before and know the layout. You must guard against their retaliation. As the saying goes: a man can be a thief for a day, but you can't guard against a thief for a thousand days. You masters have many valuable goods here; you cannot be too careful."
 
-　　[萧子山][y001]有点吃不透他的意思，刚才上了高狐狸的当，此时看孙掌柜笑容也好像狐狸似的。便警觉的一言不发。
+[Xiao Zishan][y001] couldn't quite grasp his meaning. Having just been tricked by the old fox Gao Ju, he now saw Master Sun's smile as equally foxy. He grew wary and remained silent.
 
-　　孙掌柜见他不接话茬，只好开门见山地说了，意思是他们起威镖局愿意为这宅子值夜，也就是充当夜班保安。除了坐店，这是镖局在城市里最主要的业务。
+Seeing that he wasn't taking the bait, Master Sun had to be direct. He explained that the Qiwei Escort Agency was willing to provide night watch for the residence, essentially acting as night-shift security guards. Besides guarding shops, this was the agency's main business within the city.
 
-　　值夜不是当护院，白天的事情，镖局是不管的。只有每天起更了，宅第内各房各院都落闩掌灯，镖师才进院巡逻。
+Night watch was not the same as being a full-time bodyguard. The agency was not responsible for daytime affairs. Only after the night watch began, when all the rooms and courtyards were bolted and lit, would the escort masters enter the compound to patrol.
 
-　　“若掌柜们觉得不够方便。可买几个僮仆，我们替掌柜们调教几个好手出来贴身护卫。”
+"If you masters find that inconvenient, you could buy a few servants, and we can train some skilled men for you as personal bodyguards."
 
-　　原来是推销保安服务。[萧子山][y001]想夜间保安还是不要为好，这宅里的秘密太多，镖师又都是精明强干之辈，时间久了，难免要窥出端倪来。至于教练几个护卫倒是有用，但是这些事情他不便做主。
+So, he was selling security services. [Xiao Zishan][y001] thought that night security was probably not a good idea. The residence held too many secrets, and the escort masters were sharp, capable men. Over time, they would inevitably notice something was amiss. As for training a few guards, that was useful, but he couldn't make that decision on his own.
 
-　　但是起威镖局这条线，执委会决定要充分利用的。眼下他们只有高举这一个代理人。社会接触面太狭窄。相比之下镖局是一个和社会各个层次都有交游的行业，上到达官贵人，下到土匪混混，他们都熟悉、也打得上交道，穿越众日后开展工作会很方便。
+However, the Executive Committee had decided to make full use of their connection with the Qiwei Escort Agency. Currently, they only had Gao Ju as an agent, which made their social contact too narrow. In contrast, an escort agency was a profession that interacted with all levels of society, from high officials and nobles down to bandits and thugs. They were familiar with them all and could deal with them, which would be very convenient for the transmigrators' future work.
 
-　　相比于其他行业和社会阶层，镖局的从业人员是最具有传统武德的人，重信守义。一旦能为我所用，将是可靠的帮手。
+Compared to other professions and social classes, the people in the escort business were the most imbued with traditional martial virtues, valuing trust and righteousness. Once they could be won over, they would be reliable allies.
 
-　　要人为我所用，就得市恩。但是镖局的达官们和一般人不一样，虽然为了稻粱谋，和匪人“点春”“交朋友”——那只是为了吃这碗饭。实际上交友十分慎重。想靠出手大方来博取好感是不行的，搞不好好落个“秧子”的名头，给他们看轻了。
+To make people work for you, you had to show them favor. But the masters of the escort agency were different from ordinary people. Although they negotiated and "made friends" with bandits for the sake of their livelihood, that was just part of the job. In reality, they were very cautious about whom they befriended. Trying to win their favor with generosity wouldn't work; it might even earn them the reputation of being a foolish spendthrift and cause them to be looked down upon.
 
-　　好在中国从来就是一个人情的社会，宗法的社会，亲戚宗族师徒之间的关系是最紧密的，在这上面下手要容易一些。
+A better approach was through personal connections, as China had always been a society of relationships, clans, and apprenticeships. The bonds between relatives, clan members, and masters and apprentices were the strongest.
 
-　　[萧子山][y001]按照执委会的商量好的套路说道：“此次孙常出力甚多，我们几个商量了给他脱籍。”
+Following the plan discussed with the Executive Committee, [Xiao Zishan][y001] said, "Sun Chang contributed a great deal this time. We have discussed it and decided to grant him his freedom."
 
-　　“这可是莫大恩典啊。”孙掌柜站了起来，深施一礼——虽说脱籍对奴仆来说未必就是好事，特别是脱籍之后没有去处主家又不肯收留的话，简直就是死路一条——但不管怎么说，孙常即是他的宗侄又是他的师侄，屈身为奴，他这个叔伯辈分的也脸上无光。
+"That is a tremendous act of grace!" Master Sun stood up and bowed deeply. Although freedom wasn't always a good thing for a servant—especially if they had nowhere to go and their former master wouldn't take them back, it could be a death sentence—Sun Chang was both his clan nephew and his martial nephew. His servitude was a disgrace to an elder like himself.
 
-　　“这个恩典也是他自己挣来的，”他故意瞥了一眼在一旁端茶伺候的高纤，“主子有难，不怕事，肯出头出力的，自然不能亏待。”
+"He earned this grace himself," he said, deliberately glancing at Gao Xian, who was serving tea nearby. "When the master is in trouble, those who are not afraid and are willing to step up and help should naturally not be treated poorly."
 
-　　他接着说：“孙常虽脱去奴籍，但他忠信可用。若他愿意，我们还是留他办事。”
+He continued, "Although Sun Chang is now free from servitude, he is loyal and trustworthy. If he is willing, we would like to keep him in our service."
 
-　　“孙常这孩子，您多抬举。”孙掌柜面露激动之色。镖局就算生意好了，能添上他这么一个镖师，也不过就是一辈子走南闯北护镖而已。若能留在澳洲掌柜们手下办事，日后的前途可比当个镖师强多了。
+"Please, continue to look after this boy, Sun Chang." Master Sun's face flushed with excitement. Even if the escort agency's business improved and they could take him on as an escort, he would just spend his life traveling the country guarding goods. If he could remain in the service of the Australian masters, his future prospects would be far greater than that of a mere escort.
 
-　　“以后他奔走办事，还要您这位长辈多多照应。”
+"In the future, when he is running errands for us, we will still need you, his elder, to look after him."
 
-　　“这个自然，”孙掌柜忙不迭的包拍胸脯，“掌柜们交待的事，就是起威的事。一定尽力。”
+"Naturally," Master Sun said, eagerly patting his chest. "Any matter entrusted by you masters is a matter for Qiwei. We will certainly do our utmost."
 
-　　好，有点意思了，果然还是一家人的事情尽心的多。
+*Good, this is getting interesting,* Xiao Zishan thought. *As expected, people are much more dedicated when it comes to family matters.*
 
-　　他示意高纤退出去。才又继续说：“还有便是高弟。你也见过，此处的一个僮仆。吩咐他打听市面上的各种消息。他人极机灵，又聪明。但我担心他年纪太小，长期出没市井容易学坏了，再则他身上没个功夫也容易吃亏。就请起威好好训诫他吧。镖局虽然黑白二道交游甚广，却难得持正不邪，交到你们手上，我们放心。”
+He gestured for Gao Xian to leave. Then he continued, "There is also the matter of Gao Di. You have met him, one of the servants here. We have him inquire about various news in the market. He is extremely clever and smart. But I worry that he is too young; spending too much time in the streets could lead him astray. Furthermore, without any martial skills, he could easily be taken advantage of. So, I would like to ask Qiwei to train him properly. Although the escort agency has wide connections in both the legitimate world and the underworld, it is rare to find those who can remain upright and not fall into evil. We feel at ease entrusting him to you."
 
-　　“掌柜过奖了。”孙掌柜精神焕发，澳洲的几个掌柜还真瞧得起咱爷们。
+"You praise us too highly, Shopkeeper." Master Sun was beaming. The Australian masters truly held them in high regard.
 
-　　[萧子山][y001]看火候差不多了，也不再多言，双方敷衍几句就散了。
+Seeing that the time was right, [Xiao Zishan][y001] said no more. They exchanged a few more pleasantries and parted ways.
 
-　　[萧子山][y001]当天晚上穿回去向执委会汇报了有关情况。是否让高举赊帐引起了争论，无论是同意的还是反对的，都有着极充分的理由，一时间双方谁也说服不了谁。
+That evening, [Xiao Zishan][y001] traveled back through the wormhole to report the situation to the Executive Committee. The question of whether to grant Gao Ju credit sparked a debate. Both the proponents and opponents had very strong reasons, and for a time, neither side could persuade the other.
 
-　　于鄂水的发言却是来一个思路。
+But Yu E'shui's speech offered a new line of thought.
 
-　　“那边现在是几月了？”
+"What is the date over there now?"
 
-　　“四月三十。”
+"April 30th."
 
-　　“是天启七年四月三十。”于鄂水点点头，“再过十八天，熹宗皇帝就会在祭祀方泽潭后到西苑游乐，结果风吹翻船落水。虽然被谈敬所救，但是身体就此每况愈下。”
+"The 30th of April, in the seventh year of the Tianqi reign," Yu E'shui nodded. "In another eighteen days, Emperor Xizong will go boating in the West Garden after a ritual sacrifice. His boat will be overturned by the wind, and he will fall into the water. Although he will be rescued, his health will decline from that point on."
 
-　　“他要到八月才驾崩，难道叫高举把建生祠的事情拖到八月？恐怕你装神弄鬼也不可能让他有这么大胆子等皇帝死吧。”反应快的人已经明白了他的思路。
+"He doesn't die until August. Are you suggesting we tell Gao Ju to drag out the construction of the living shrine until then? I doubt even your hocus-pocus could make him bold enough to wait for the emperor to die," someone with a quick mind said, having already grasped his idea.
 
-　　“呵呵，你太小看官僚的对政治风向的灵敏度了。”于鄂水说，“魏忠贤凭什么当上九千九百岁，不就是靠着皇帝对他的宠信吗？他的一身荣辱都取决于熹宗皇帝的生死。天启本身身体就不好，这次落水之后一直没有恢复。皇帝一死，必然是信王即位，魏忠贤就算不倒，也不可能象天启朝那样弄权了。既然这样，官僚们就不会在这样局势不明的情况下急于表态。
+"Hehe, you underestimate the sensitivity of bureaucrats to political winds," Yu E'shui said. "How did Wei Zhongxian become the 'Nine Thousand Nine Hundred Year Old'? Wasn't it through the emperor's favor and trust? His entire honor and disgrace depend on the life and death of Emperor Xizong. Tianqi himself was not in good health, and he never recovered after falling into the water. Once the emperor dies, the Prince of Xin will inevitably ascend the throne. Even if Wei Zhongxian doesn't fall, he won't be able to wield power as he did during the Tianqi reign. Given this, bureaucrats will not be eager to take a stand in such an uncertain situation.
 
-　　“这个杨公公既然本来就不是魏忠贤一党，不过想乘这个机会去讨好一下，如果局势忽然变得不明了了，恐怕他第一个要推迟此事。不去出头建生祠，也就是维持现状；建了，万一皇帝驾崩，新主即位事情十有八九要翻过来，他不是给自己添堵？”
+"Since this Eunuch Yang was not originally part of Wei Zhongxian's faction and was just trying to curry favor, if the situation suddenly becomes unclear, he will probably be the first to postpone this matter. Not building the living shrine maintains the status quo. Building it, only for the emperor to die and the new ruler to reverse everything, would just be asking for trouble, wouldn't it?"
 
-　　“难道魏忠贤就眼睁睁地看着信王即位？我们知道天启以后是崇祯，那些官僚可不知道。”
+"Would Wei Zhongxian just watch as the Prince of Xin ascends the throne? We know that Chongzhen comes after Tianqi, but those officials don't."
 
-　　“天启没有子嗣的，当然只能传兄弟。”有人解释了。
+"Tianqi has no surviving sons, so of course, the throne can only pass to his brother," someone explained.
 
-　　“其实天启一共有过三个儿子，但是都未成年。根据史籍记载和现代史家研究认为，皇子很可能是为魏、客二人所害的。到天启七年的时候，他最小的儿子已经殇了二年。皇帝一旦生病不起，可传位者只有兄弟信王由检了。
+"Actually, Tianqi had three sons, but none survived to adulthood. According to historical records and modern research, it is believed the princes were likely harmed by Wei Zhongxian and his nanny, Madam Ke. By the seventh year of Tianqi, his youngest son had been dead for two years. If the emperor falls ill and cannot recover, the only one who can inherit the throne is his brother, Zhu Youjian, the Prince of Xin.
 
-　　“天启虽然昏聩，但是对他的皇后张氏和五弟由检注重情义。魏忠贤曾经企图制造大案，构陷皇后的父亲张国纪‘谋立信王’，由此打击异己。司礼监太监王体乾知道皇帝的脾性，力劝说：‘主上凡事愦愦，独兄弟夫妇间不薄，如有不测，我辈没命了’，魏忠贤听了大惊失色，赶紧取消了计划。可见熹宗皇帝对皇后和信王的信任众人皆知。除非天启又有了子嗣，否则皇帝驾崩，信王即位是板上钉钉的事情。官僚们都十分清楚。”
+"Although Tianqi was muddle-headed, he cared deeply for his empress, Zhang, and his fifth brother, Youjian. Wei Zhongxian once tried to frame the empress's father, Zhang Guoji, for 'plotting to install the Prince of Xin' to attack his enemies. The eunuch Wang Tiqian, knowing the emperor's temperament, strongly advised against it, saying, 'His Majesty is muddled in all things, but he is not unkind to his brother and wife. If something were to happen, we would all lose our lives.' Wei Zhongxian was terrified and quickly canceled the plan. It is clear that the emperor's trust in the empress and the Prince of Xin was well known. Unless Tianqi has another son, it is a foregone conclusion that the Prince of Xin will ascend the throne upon the emperor's death. The officials are all very clear on this."
 
-　　“皇帝一生病，魏忠贤这只大明股票市场上的绩优股就会岌岌可危，信王这只潜力股自然就被大家看好。这个时候还会有人去大量买进说不定明天就会跌破发行价甚至干脆停牌的股票么？”
+"Once the emperor falls ill, Wei Zhongxian, the blue-chip stock of the Great Ming stock market, will become precarious. The Prince of Xin, the potential growth stock, will naturally be favored by everyone. At that time, will anyone still be buying large quantities of a stock that might fall below its issue price or even be delisted tomorrow?"
 
-　　“那我就通知高举拖过五月十八了？”
+"So, I should just tell Gao Ju to delay past May 18th?"
 
-　　“消息没这么快吧？北京的消息传到广州最快也得十来天吧。不如通知他拖到五月底自见分晓。”
+"The news won't travel that fast, will it? It would take at least ten days for news from Beijing to reach Guangzhou. It would be better to tell him to delay until the end of May, and the situation will resolve itself."
 
-　　“呵呵，虽然我不赞同装神弄鬼的事情，但是我觉得这件事情上，可以小小得显示一下预测能力——明确说出五月十八朝局即有变。预测未来对任何人来说都有很强的诱惑力，何况预测这样重大的朝局变动。一旦验印这个杀伤力可是很大的。虽然不至于能让别人倒头便拜当小弟，也能充分增加我们是顺应天命的气氛。”于鄂水笑着说。
+"Hehe, although I don't approve of playing god, I think in this matter, we can show a little predictive ability—clearly state that on May 18th, there will be a change in the court situation. Predicting the future is a powerful temptation for anyone, especially predicting such a major political shift. Once it is verified, the impact will be enormous. While it won't make people bow down and become our followers, it will greatly enhance the atmosphere that we are acting in accordance with the Mandate of Heaven," Yu E'shui said with a smile.
 
-　　这个解决方法不仅奇特，而且大大满足了穿越者们充当“先知”的嗜好。一时间还有人出主意说要于鄂水充当“先知”去和高举和小杨公公面谈，另有人干脆建议于鄂水进京找曹化淳的，说不定以后崇祯那里就有了拥戴之功，穿越者就可以用现代科技和理念直接改造皇帝，把中国带入民主、和谐、发达的大明盛世……
+This solution was not only unique but also greatly satisfied the transmigrators' desire to act as "prophets." For a moment, some even suggested that Yu E'shui should act as the "prophet" and meet with Gao Ju and the young Eunuch Yang. Others went so far as to suggest that Yu E'shui go to Beijing to find Cao Huachun, hoping to gain favor with the future Chongzhen Emperor. Then, the transmigrators could use modern technology and ideas to directly reform the emperor and lead China into a democratic, harmonious, and prosperous Ming era...
 
-　　于鄂水顿时就倒了胃口：这帮人难道以为东厂和锦衣卫是聋子的耳朵？这样妄言帝王生死的“妖言”，不马上给抓到诏狱里去品尝公公们的酷刑才怪。就算曹化淳愿意听这疯疯癫癫的话，信王这会正韬光养晦，连近侍都不大见，还见什么“先知”！真要出了这个决议，谁愿意当先知谁去，他可不凑这个热闹。
+Yu E'shui was instantly disgusted. Did these people think the Eastern Depot and the Embroidered Uniform Guard were deaf? Such "malicious rumors" about the emperor's life and death would get them immediately arrested and thrown into the imperial prison to taste the eunuchs' tortures. Even if Cao Huachun were willing to listen to such madness, the Prince of Xin was currently lying low and barely seeing his own attendants, let alone some "prophet"! If this resolution were to pass, whoever wanted to be the prophet could go; he wasn't joining that circus.
 
-　　幸好头脑发热者不算多，这个异想天开的决议没有通过。于鄂水这才有出了一些细节上的主意：如不要说得太明白，以免吓坏了高举，恐惧会引起很多意想不到的事情。只说五月十八必有大变就可以。而且不能说是自己知道的，要说有人夜观天象云云，反正就得云山雾罩。
+Fortunately, there weren't many hotheads, and this fanciful resolution did not pass. Yu E'shui then offered some detailed advice: for example, not to be too explicit, so as not to frighten Gao Ju. Fear could lead to many unexpected things. Just saying that there would be a great change on May 18th would be enough. And they couldn't say they knew it themselves; they had to attribute it to someone observing the celestial phenomena or something equally vague and mysterious.
 
-　　“有一点千万记得，不要说魏忠贤会倒台或者皇帝什么时候会死。这样事关重大的话，高举肯定会去告诉小杨公公，以这些人的禀性，不为立功就为了避祸也会马上把你告发拘捕！”于鄂水最后对他们强调着。
-[y001]: /characters/y001 "萧子山"
+"There is one thing you must remember: do not say that Wei Zhongxian will fall or when the emperor will die. For words of such great importance, Gao Ju will definitely tell the young Eunuch Yang. Given their nature, they would immediately report and arrest you, if not to gain merit, then to avoid disaster!" Yu E'shui emphasized to them in the end.
+[y001]: /characters/y001 "Xiao Zishan"
