--- a/_posts/2009-10-7-1-03700.md
+++ b/_posts/2009-10-7-1-03700.md
@@ -1,132 +1,134 @@
 ---
 layout: post
-title: 第三十七节 暂别大明
+title: "Section 37: A Temporary Farewell to the Great Ming"
 category: 1
 path: 2009-10-7-1-03700.md
 tag: [normal]
 ---
 
-　　“阿姆斯特丹……不，广州，我会回来的。”[萧子山][y001]站在庭院里，望着远处蓝天下坡山上的岭南第一楼，红砂岩的楼体重檐歇顶的古建筑——哦，不是古建筑。他不自觉地笑了一下，“是现代建筑。”
+"Amsterdam... no, Guangzhou, I shall return." [Xiao Zishan][y001] stood in the courtyard, gazing at the Zhenhai Tower, the number one tower of Lingnan, on a distant hill under the blue sky. The ancient building with its red sandstone walls and double-eaved hip-and-gable roof—oh, not an ancient building. He smiled unconsciously. "It's a modern building."
 
-　　这青砖铺地，粉墙黛瓦，充满了岭南风味的住宅。[萧子山][y001]记得，在21世纪，这里应该是惠福路。一条价廉物美的食肆街，其中不乏经营了几十年的名家。他去过吃过那里的“银记”肠粉、“成记”粥粉面……本时空的此地，却是一个相当荒芜的地方。虽然可以看到民居，但是期间还是夹杂著废园甚至农田菜地，杂树林、小池塘随处可见。
+This residence, with its blue brick floors, white walls, and dark tiles, was full of Lingnan flavor. [Xiao Zishan][y001] remembered that in the 21st century, this area should be Huifu Road, a street of cheap and delicious eateries, many of which were famous establishments that had been in business for decades. He had eaten at "Yin Ji" for their rice noodle rolls and "Cheng Ji" for their congee and noodles... In this time, however, the place was quite desolate. Although there were houses, they were interspersed with abandoned gardens, farmland, vegetable plots, groves of trees, and small ponds.
 
-　　[萧子山][y001]从小就对这样的场景十分熟悉，小时候住的南方城市和这里很像。中国的传统城市，城峘之内有农田荒地。某些地方，到60－70年代还有城里的农村——在市区里，却有大片的农田和村舍，甚至还有生产队的编制。
+[Xiao Zishan][y001] was very familiar with such scenes from his childhood. The southern city where he grew up was very similar. Traditional Chinese cities had farmland and wasteland within their walls. In some places, even in the 1960s and 70s, there were still "urban villages"—large tracts of farmland and cottages, even with production team structures, right in the middle of the city.
 
-　　这里已经选做了日后穿越政权在广州的据点。濠畔街的那处，现在只是作为一个穿越贸易点使用，将来则是一处备用据点。
+This place had been chosen as the future stronghold of the transmigrator regime in Guangzhou. The one on Haopan Street would now only be used as a trading post and a backup location.
 
-　　新宅是高举花的钱，但是地方却是孙常找的——[萧子山][y001]现在越来越喜欢这个年轻人了，办事利落，而且善于理解穿越者的想法。
+The new residence was paid for by Gao Ju, but the location was found by Sun Chang. [Xiao Zishan][y001] was growing increasingly fond of this young man; he was efficient and good at understanding the transmigrators' way of thinking.
 
-　　找得这处宅子，地势却比周边要高出一些来，面积很不规则，两面环水，最早修建房子的主人建造了一所小小的宅子，把余下的空地建造一个园林。如今这里几经转卖，和园林都已经荒废成一片瓦砾荆棘遍布的废地，只有园里的一池碧水、半座假山、几棵大树和一个还没完全倒下来来的亭子才透露出一丝这里曾经的风光。
+The residence he found was on slightly higher ground than its surroundings. The plot was irregular in shape and bordered by water on two sides. The original owner had built a small house and used the remaining land to create a garden. Now, after changing hands several times, both the house and the garden had fallen into ruin, a wasteland of rubble and thorns. Only a pond of green water, half a rockery, a few large trees, and a pavilion that had not yet completely collapsed hinted at its former glory.
 
-　　孙常找得几处宅子里这处是最破败的，价钱也便宜——房院几乎都要重修。但是四处冷僻安静，面积又大，扩展有很大的余地。当下就决定买下来。
+Of the several properties Sun Chang had found, this one was the most dilapidated and also the cheapest—the house and courtyard needed almost complete rebuilding. But it was secluded and quiet, with a large area that offered great potential for expansion. They decided to buy it on the spot.
 
-　　整个房屋的重修方案完全由穿越者中的建筑设计人员完成。其设计思路是：在不破坏该宅第的整体明代外观的情况下，内部进行现代化的改造，以适应穿越者未来在广州以其为据点的需求。
+The entire renovation plan was drawn up by the architects among the transmigrators. The design philosophy was to carry out modern renovations on the interior to meet the future needs of the transmigrators using it as a base, without destroying the overall Ming Dynasty appearance of the residence.
 
-　　在执委会的对广州据点的未来用途中，这个地方将作为穿越众在广东沿海的贸易、情报和通讯中心。
+In the Executive Committee's plans for the Guangzhou outpost, this place would serve as the transmigrators' center for trade, intelligence, and communications on the Guangdong coast.
 
-　　建筑师保留了原来的住宅的结构面貌，只做全面的整修和加固，这个部分将作为与当地人打交道的场所。
+The architects preserved the structural appearance of the original residence, only carrying out comprehensive repairs and reinforcements. This part would serve as the area for interacting with the locals.
 
-　　废园划出靠近宅子的一部分作为园林进行修复。其他面积，全部规划为各种现代设施，包括计划中的办公室、宿舍、监控室、电报室、仓库、金库。当然这些房子都会有一个传统院落建筑的外表。内部设施和结构将完全按照现代建筑原则，以利最大限度的利用空间。
+A portion of the ruined garden near the house was marked for restoration. The rest of the area was planned for various modern facilities, including offices, dormitories, a surveillance room, a telegraph room, a warehouse, and a vault. Of course, all these buildings would have the exterior of traditional courtyard architecture. The internal facilities and structure would be designed entirely according to modern architectural principles to maximize the use of space.
 
-　　穿越众要在据点内安排各种技防设施和联络设备就涉及到用电的问题。城里用风力发电显然是行不通的，且不说风力有限，那个又高又大的架子也未免太显眼了。太阳能发电效率也过低。虽然一时间执委会还找不到能安全稳妥的把发电机送进广州据点的方法，但还是准备显修建一个地下的，有隔音设施的发电机房——有备无患。
+Arranging various technical security and communication equipment in the stronghold involved the problem of electricity. Wind power was clearly not feasible in the city; not only was the wind power limited, but the tall and large structure would be too conspicuous. Solar power was also too inefficient. Although the Executive Committee couldn't find a safe and reliable way to get a generator into the Guangzhou outpost for the time being, they still prepared to build an underground, soundproofed generator room—just in case.
 
-　　园内和宅内都有水井，经过检测大体还合格，请当地淘井工人深淘一次，即可做生活用水，饮用水则只好用井水进行水质净化处理了。
+There were wells in both the garden and the residence. After testing, the water quality was generally acceptable. They would hire local well-diggers to dredge them thoroughly for daily use. Drinking water would have to be purified from the well water.
 
-　　虽然在相当长一段时间里这个广州据点即没有电也没有自来水，但是在修建中将把未来需要添置设备和铺设线路的地方都预先开好暗槽。
+Although the Guangzhou outpost would have neither electricity nor running water for a considerable time, during construction, they would pre-install hidden conduits for future equipment and wiring.
 
-　　防御方面，疏浚原先西北两面的小河和池塘，修整驳岸。原先已经塌毁的不堪的院墙统一增加到6米高，这里大户人家的后院墙，甚至有高到8－9米的。并在墙体上种上爬藤类的蔷薇花——密密麻麻的尖刺也能起到一定的防盗效果。
+For defense, they would dredge the small river and pond on the northwest sides and repair the banks. The crumbling courtyard walls would be uniformly raised to a height of six meters. The backyard walls of large households here could be as high as eight or nine meters. They would also plant climbing roses on the walls—the dense thorns would provide some anti-theft effect.
 
-　　不过这一切，此刻只留在设计师的电脑上，目前的资金并不宽裕，不宜再在一个不太急需的项目上进行过多投资。虫洞的能量即将消失，为了保存最后的能量，穿越贸易在这次之后将停止，在明代时空活动了好几个月的穿越者们将全部撤回本时空，直到最后穿越行动的到来。
+However, all of this currently existed only on the designers' computers. Funds were tight at the moment, and it was not advisable to invest too much in a project that was not urgently needed. The wormhole's energy was about to fade. To conserve the last of its energy, the trans-temporal trade would cease after this trip. The transmigrators who had been active in the Ming Dynasty for several months would all be withdrawn to their own time until the final transmigration.
 
-　　因此这个宏伟的建筑计划，此时仅仅实行了一小部分，孙常请来泥水匠人们，正在修缮宅第和四面的墙壁。看著工人们忙忙碌碌的运砖拌泥，[萧子山][y001]有点留恋起这里来了，不知道要再过多久才能从新回到这里。
+Therefore, only a small part of this grand construction plan was being implemented at the moment. Sun Chang had hired masons who were currently repairing the residence and the surrounding walls. Watching the workers busily carrying bricks and mixing mortar, [Xiao Zishan][y001] felt a little reluctant to leave. He didn't know how long it would be before he could return.
 
-　　正式穿越之后，他们就不再是人畜无害，带着新奇商品货物来这里赚钱的澳洲商人，而是独树一帜，意图谋反的一股政治势力。自己作为执委会的一员不大可能再被派到这敌方势力下的广州城了。不知道要过多久，穿越者的旗帜，才能在这岭南第一楼上飘扬呢？
+After the official transmigration, they would no longer be harmless Australian merchants coming here to make money with novel goods, but a unique political force with rebellious intentions. As a member of the Executive Committee, it was unlikely he would be sent back to Guangzhou, which would be under enemy control. He wondered how long it would be before the transmigrators' flag could fly over the Zhenhai Tower.
 
-　　正想着，看到[文德嗣][y002]已经满面春风的从外面进来了。最近一周[萧子山][y001]都在新宅里监工，穿越贸易的事情就由[文总][y002]和[王工][y003]负责了
+As he was lost in thought, he saw [Wen Desi][y002] walk in from outside, his face beaming. For the past week, [Xiao Zishan][y001] had been supervising the work at the new residence, while [Director Wen][y002] and [Engineer Wang][y003] were in charge of the trade.
 
-　　“[子山][y001]，还在监工？”
+"[Zishan][y001], still supervising the work?"
 
-　　“[文总][y002]你怎么跑这里来了？你最近要少露面。”
+"[Director Wen][y002], what are you doing here? You should be keeping a low profile these days."
 
-　　“不碍事，有起威的镖师跟着，又有我的护身法宝……”
+"It's fine. I have escorts from the Qiwei agency with me, plus my own talismans..."
 
-　　“呵呵，又是那老三样吧：喷剂、折刀、防刺背心？”
+"Hehe, the same old three, right? Pepper spray, folding knife, and anti-stab vest?"
 
-　　“不，吸取了上次的教训，我又添了一个简易防毒口罩。”[文总][y002]拍了拍那鼓起来的腰部。他刚刚去拜会了高举，把于鄂水的那套说辞云山雾罩的胡诌了一番。
+"No, I've learned my lesson from last time. I've added a simple gas mask." [Director Wen][y002] patted his bulging waist. He had just paid a visit to Gao Ju and spun Yu E'shui's vague prophecy.
 
-　　“高举什么表情？”
+"What was Gao Ju's expression?"
 
-　　“难讲！”[文德嗣][y002]想了下，“一口气吃了十几个青橄榄的模样！不过，他知道我们临走肯把货物都赊给他，又感动的想哭……”
+"Hard to say!" [Wen Desi][y002] thought for a moment. "Like he had just eaten a dozen green olives in one go! But, when he found out we were willing to give him all the goods on credit before we left, he was so moved he almost cried..."
 
-　　两个人都哈哈大笑起来。
+Both of them burst out laughing.
 
-　　考虑到将来穿越之后很长一个时期内，穿越者不能象现在一样轻易拿出大量的所谓澳洲货了。所以经过讨论，还是赊给了高老爷一大批货物，把个高举感动的差点掉了眼泪，这批货物价值二十万两！其实对执委会来说这次赊欠也没多大风险，合计人民币也不过三万多而已。不会影响到本时空这边的资金使用。
+Considering that for a long period after the transmigration, they would not be able to easily produce large quantities of so-called Australian goods as they could now, they had decided after discussion to extend a large line of credit to Master Gao. Gao Ju was so moved he nearly shed tears. The shipment was worth two hundred thousand taels! In reality, the risk for the Executive Committee wasn't that great; the cost was only a little over thirty thousand RMB. It wouldn't affect the use of funds in their own time.
 
-　　“那他也付了不少钱吧？”
+"He must have paid a lot of money too, right?"
 
-　　“二千两黄金。还有许多过去我们不大敢卖的东西，反正这是最后一次了，卖完走人。”[文德嗣][y002]止住了笑，“这些是我们穿越前的最后一笔收入了。”
+"Two thousand taels of gold. And many things we didn't dare to sell before. Anyway, this is the last time. Sell it all and leave." [Wen Desi][y002] stopped laughing. "This is our last income before the transmigration."
 
-　　“够用么？”
+"Is it enough?"
 
-　　“核算过几遍了，不算这次的收入，目前的储备就够了，还打了一个二百万的富裕应急。”
+"We've calculated it several times. Not counting this income, our current reserves are sufficient. We even have a two-million emergency fund."
 
-　　“我到时候又有人提出来要什么新的东西。”
+"I'm just worried someone will propose something new at the last minute."
 
-　　“不够就不买了，该有的都核算进去了要再添什么也是锦上添花，可有可无。”
+"If we don't have enough, we won't buy it. Everything necessary has been accounted for. Anything else would just be icing on the cake, nice to have but not essential."
 
-　　“就怕有什么关键的东西我们没想到。我们可是要去重建一个完整的工业体系。别在节骨眼上掉了链子。”[萧子山][y001]依旧是悲观主义者。
+"I'm just afraid there's something crucial we've overlooked. We are going to rebuild a complete industrial system. We can't afford to drop the ball at a critical moment." [Xiao Zishan][y001] remained a pessimist.
 
-　　“不说扫兴的话了，我们把这里的事情也都料理一下。”[文德嗣][y002]说。
+"Let's not talk about depressing things. Let's get things settled here," [Wen Desi][y002] said.
 
-　　回到刚刚修好的屋子里，孙常拿着个账本正在屋里候着。他现在隐隐已是管事的意思了。把这么大一份家业托付给认识不到三个月的人，换作现代，那是谁都不会干的，但是此时此地，穿越者们别无选择，只有信任了。
+Back in the newly repaired house, Sun Chang was waiting with a ledger. He was now implicitly the steward. Entrusting such a large property to someone they had known for less than three months was something no one would do in the modern world, but here and now, the transmigrators had no other choice but to trust him.
 
-　　“孙常，我们这次回澳洲去了。下次再来，应是明年了。你在此好生看守宅院，切勿生事。遇事对与孙掌柜商议。若有为难事，亦可去求教高举高老爷，我都和他说说过，他定会见你。”
+"Sun Chang, we are returning to Australia this time. We should be back next year. You are to look after this residence well and not cause any trouble. If you encounter any problems, discuss them with Master Sun. If there are any difficulties, you can also seek help from Master Gao Ju. I have spoken with him, and he will definitely see you."
 
-　　“是。请老爷们示下，下次小的们去哪里迎接老爷？”
+"Yes. May I ask, masters, where should we welcome you next time?"
 
-　　“不用，我们来了自会派人与你联系，”[文德嗣][y002]从怀里掏出一个用锯子锯开的铝制纪念章，分了一半给他，“到时候，以此为记，你可听来人吩咐。”
+"No need. We will send someone to contact you when we arrive." [Wen Desi][y002] took out an aluminum commemorative medallion that had been sawn in half and gave one half to him. "At that time, use this as a token. You can follow the instructions of the person who comes."
 
-　　“是，还有一事想请老爷示下。”
+"Yes. There is one more thing I would like to ask, master."
 
-　　“什么事？”
+"What is it?"
 
-　　“这宅院如此广大，仅我一个，怕看管不力。能否请老爷再收买一二房家人？”
+"This residence is so large. I am afraid I cannot manage it alone. May I ask the masters to purchase one or two more household servants?"
 
-　　“不必了，我们回去之后，高青一家就搬来这里。高弟又在你师伯那里学艺，你平日里也要多教他，不要长大了像他那个没出息的爹。”
+"No need. After we leave, Gao Qing's family will move here. Gao Di is learning from your martial uncle. You should also teach him more in your spare time, so he doesn't grow up to be like his worthless father."
 
-　　“家中一切银钱出入，都归你开销，高弟负责记账。高青一家的银钱月米，都有了定额，按章发给就是。你的月银是二两，月米半石。”
+"All the household's finances will be managed by you, and Gao Di will be in charge of bookkeeping. Gao Qing's family will have a fixed monthly allowance of silver and rice, which you will distribute according to the rules. Your monthly salary is two taels of silver and half a shi of rice."
 
-　　“喏。”
+"Understood."
 
-　　“虽说是叫你切勿生事，可不是要你们呆在屋子里宅！”
+"Although I told you not to cause trouble, that doesn't mean you should just stay cooped up in the house!"
 
-　　“？”孙常一脸迷惑。
+"?" Sun Chang looked confused.
 
-　　[文德嗣][y002]意识到自己说漏了嘴，也不改口，继续一脸严肃的训诫道：“多去四下走动，打听消息。日后我们来了，再禀报过来。”
+[Wen Desi][y002] realized he had let a modern slang slip, but he didn't correct himself and continued with a serious expression, "Go out and walk around more, gather information. When we return, you will report it to us."
 
-　　“是。”
+"Yes."
 
-　　“好生候着，我们就要回来的。”
+"Wait for us patiently. We will be back."
 
-　　穿越者们离开的第二天，高青一家正收拾着家什物件准备搬到澳洲老爷的新宅里去。阎管事又在宅门口叫高青出来。
+***
 
-　　高青听得声音刚要出去，他老婆发起飙来：
+The day after the transmigrators left, Gao Qing's family was packing their belongings to move to the Australian masters' new residence. Steward Yan once again called for Gao Qing at the gate.
 
-　　“去去去，你去啊，再去好好的献殷勤吧！咱们先进得门，倒叫后来孙常脱籍当了管事，你倒好！先进的门闹半天还是一个打杂的！”
+As Gao Qing heard the voice and was about to go out, his wife exploded.
 
-　　高青窝窝囊囊的不吭气，意思是还想往外走。
+"Go, go, go ahead! Go and suck up to them again! We came here first, but the newcomer Sun Chang gets his freedom and becomes the steward, and look at you! After all this time, you're still just a handyman!"
 
-　　高纤干脆又哭又闹起来了：“我跟了你这个窝囊废算是倒了八辈子的霉了，你还有点脑汁子没有，高家给咱们什么？[文老爷][y002]他们待咱们怎么样？你倒好，去卖他们还倒贴钱！”
+Gao Qing remained silent and meek, but he still wanted to go out.
 
-　　“[文老爷][y002]总是外藩人……以后……”
+Gao Xian started crying and shouting, "I must have had eight lifetimes of bad luck to end up with a useless man like you! Do you have any brains left? What did the Gao family ever give us? And how did [Master Wen][y002] and the others treat us? And you! You sell them out and even pay for the privilege!"
 
-　　“外藩人怎么着了？待咱们好跟着去天涯海角我也乐意！你就去卖吧，留在高家当你的好奴才！”
+"[Master Wen][y002] is a foreigner, after all... in the future..."
 
-　　他们的一双儿女，看着娘大发脾气，一声不吭。两个孩子都到了已经懂事的年龄，知道爹娘各有各的想法，但是感情上都觉得澳洲来的老爷好，说话又和气，平日里有经常给好吃好玩的澳洲小物件。心里自然是偏着娘这边的。
+"So what if he's a foreigner? He treats us well! I'd follow him to the ends of the earth! You just go ahead and sell them out! Stay in the Gao family and be their good little slave!"
 
-　　高青垂着脑袋不说话，乘这个机会，高纤已经走了出去，满面堆笑对着阎管事说：“真不巧了，我们家男人一早就去那边宅里收拾屋子去了。奴家正带着孩子收拾东西呢，收受完了就过去，您有什么事，明个叫他过来给您回话？”
+Their two children, watching their mother's outburst, said nothing. They were old enough to understand that their parents had different ideas, but emotionally, they both felt that the Australian masters were good. They spoke kindly and often gave them delicious food and fun little Australian trinkets. In their hearts, they naturally sided with their mother.
 
-　　阎管事知道她在撒谎，也不敢奈何她，只好讪讪走了，心里暗暗骂道：这群海外番商真他妈的会灌迷汤！才几天，一个一个都忠心不二了！
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
+Gao Qing hung his head in silence. Seizing the opportunity, Gao Xian had already gone out. With a broad smile, she said to Steward Yan, "What a coincidence, my husband went to the new residence early this morning to tidy up. I'm just packing things up with the children. As soon as we're done, we'll head over. If you have any business, why don't you have him come back to you tomorrow?"
+
+Steward Yan knew she was lying but didn't dare to challenge her. He left resentfully, cursing under his breath: *These damn foreign sea merchants really know how to cast a spell! It's only been a few days, and every single one of them is fiercely loyal!*
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
