--- a/_posts/2009-10-8-1-03800.md
+++ b/_posts/2009-10-8-1-03800.md
@@ -1,105 +1,107 @@
 ---
 layout: post
-title: 第三十八节 意外来客
+title: "Section 38: An Unexpected Visitor"
 category: 1
 path: 2009-10-8-1-03800.md
 tag: [normal]
 ---
 
-　　一年后。
+One year later.
 
-　　中国南方，某大城市
+A large city in Southern China.
 
-　　郭逸走进办公室。他是个共和国的公务员，不过今天比规定的时间迟了那么一点上班——昨晚上和过去的几个老同学吃饭，多喝了几杯。
+Guo Yi walked into his office. He was a civil servant of the Republic, but today he was a little later than the prescribed time—he had dinner with some old classmates last night and had a few too many drinks.
 
-　　老同学见面，喝酒是难免的，但是喝多了的人往往不是因为高兴。
+When old classmates meet, drinking is inevitable, but those who drink too much are often not doing it out of happiness.
 
-　　混得好的，自然牛皮连天，巴不得每个人都知道他如何的成功，混得不好的，干脆也就不出现了。
+Those who were doing well would naturally boast endlessly, wishing everyone knew how successful they were. Those who weren't doing well simply didn't show up.
 
-　　他这样中不溜的，心情其实最郁闷……
+For someone like him, stuck in the middle, the mood was actually the most depressing...
 
-　　混得好的，瞧不上他们，讥讽他们是混安逸饭吃，没抱负；混得不好的，总觉得他们是不干活拿人民的血汗钱……
+Those doing well looked down on them, mocking them for living a comfortable, ambitionless life. Those not doing well always felt they were living off the people's hard-earned money without doing any real work...
 
-　　桌面上放着一些资料，都是些最新的社会动向的材料——郭逸是在一个专门维护社会安定团结和谐稳定的部门工作。
+On his desk were some documents, all materials on the latest social trends—Guo Yi worked in a department dedicated to maintaining social stability, unity, and harmony.
 
-　　例行公事地看了几份没什么花样的材料之后，翻到一份标记着“待办”签条的材料是广东沿海某市的一个动态通报。该地区一处闲置的海上民兵训练基地里，近一年来一直聚集了群奇怪的人，每天都在那里搞军训，练队列，跑步，还有其他军体训练活动。晚上还开会到很晚，貌似还有喊口号的声音。有人怀疑是在搞传销，举报到工商局去，工商执法大队去检查了一次，没查到传销的迹象；当地派出所也去走访过，也没发现什么违法乱纪的事。负责人解释说这是公司在进行员工岗前培训。查了营业执照什么的，确实有这么家公司，成立一年多了，这个民兵训练基地就是该公司向当地人武部租来的。
+After routinely going through a few uninteresting reports, he came across a file marked with a "To-Do" tag. It was a dynamic bulletin from a certain city on the coast of Guangdong. For nearly a year, a group of strange people had been gathering at a disused maritime militia training base in the area. They were conducting military training every day—drills, running, and other physical training activities. They also held meetings late into the night, and there seemed to be sounds of slogan-shouting. Someone suspected it was a pyramid scheme and reported it to the Administration for Industry and Commerce. The enforcement team went to investigate but found no signs of a pyramid scheme. The local police station also paid a visit but found no illegal activities. The person in charge explained that it was pre-employment training for his company. They checked the business license and other documents; there was indeed such a company, established over a year ago. The militia training base was leased by the company from the local People's Armed Forces Department.
 
-　　但是这个情况还是让人觉得可疑。于是这份通报就七转八弯的到了郭逸领导的桌上。领导指示：“有空的话，就去查一下。看看有没有什么问题。”
+But the situation still felt suspicious. And so, this bulletin made its way, through various channels, to the desk of Guo Yi's superior. The leader instructed: "If you have time, go check it out. See if there are any problems."
 
-　　情报工作也好，稳定工作也好，坐办公室看材料永远是主要的工作内容。
+Whether it was intelligence work or stability work, sitting in an office and reading materials was always the main content of the job.
 
-　　材料里涉及的一个人物叫[文德嗣][y002]，从注册资料看，他是该公司的法人、董事长兼总经理。
+A name mentioned in the material was [Wen Desi][y002]. According to the registration information, he was the company's legal representative, chairman, and general manager.
 
-　　郭逸以前没看过这人的资料。话说这[文总][y002]也不是能在他们这里挂号的人物。不过，在局子里面他是出名的喜欢看翻材料查档案的人。这个爱好让他得罪过人——他自己都不知道那些他翻出来的资料得罪了谁——于是就在本部门几轮提拔之后，依然当他的科员，而且一切能立功的工作都和他没有关系了。
+Guo Yi had never seen this person's file before. To be fair, [Director Wen][y002] wasn't the kind of person who would normally be on their radar. However, Guo Yi was known in the bureau for his love of digging through old files and archives. This hobby had earned him enemies—he himself didn't even know who he had offended with the files he dug up—and so, after several rounds of promotions within the department, he remained a regular staff member, and all opportunities for meritorious work passed him by.
 
-　　调集了[文德嗣][y002]的材料来看，这是一个普通的没什么特点的人物，三十多岁，曾经是几家企业的工程师和管理人员，收入不错。平时喜欢旅游，对历史和军事都有很大的兴趣，还搞点手工制作什么的，是个野外运动和武器爱好者，还是什么“生存狂人”，一天到晚准备挖洞过核冬天——大概他家里储备了许多食品物质吧？但是没证据表明他持有或者企图持有什么武器，连各类狗都没有。他还常上一些网站，发表一些询问的帖子，例如什么子弹更便宜、野外活动的设备之类的。身世清白，没有任何不良记录，连交通违章都查不到。
+He pulled up [Wen Desi][y002]'s file. It described an ordinary, unremarkable person in his thirties, formerly an engineer and manager at several companies, with a good income. He enjoyed traveling, had a great interest in history and military affairs, and dabbled in handicrafts. He was an outdoor sports and weapons enthusiast, and a so-called "survivalist," constantly preparing to dig a shelter for the nuclear winter—perhaps he had a large stockpile of food at home? But there was no evidence that he possessed or attempted to possess any weapons, not even any kind of dog. He frequented some websites, posting inquiries about things like which bullets were cheaper and what kind of outdoor equipment to get. His background was clean, with no adverse records, not even a traffic violation.
 
-　　他名下的这家公司是半年前注册的，注册资本一百万。郭逸当然知道注册资本都是空的，但是以这个[文总][y002]过去上班时候缴的个人所得税推测，拿一百万资本出来也没什么难的——查询了[文德嗣][y002]的银行记录：半年前他分几次提空了银行存款。前后有八十多万，在这以后，他的个人账户上就没这么多的固定存款了。
+His company was registered six months ago with a capital of one million yuan. Guo Yi knew, of course, that registered capital was often just for show, but based on the personal income tax [Director Wen][y002] had paid when he was employed, coming up with a million in capital wouldn't have been difficult. A check of [Wen Desi][y002]'s bank records confirmed this: six months ago, he had withdrawn his entire savings in several transactions, totaling over eight hundred thousand yuan. After that, his personal account no longer held such a large fixed deposit.
 
-　　公司账号来往上，也看不出什么名堂，正常的经营往来，买进卖出的。列支的费用有：工资、水电办公费支出。账号上有现金，但是不多，只保持着十几万上下的水平。
+The company's bank account transactions also revealed nothing unusual—normal business dealings, buying and selling. The listed expenses included salaries, utilities, and office fees. There was cash in the account, but not much, maintaining a level of around one hundred thousand yuan.
 
-　　郭逸又查了税务局的资料，证实了他的想法——这公司业务活动都是正常的开展，税费也一分不少的缴纳了，虽然发现过一些财务上的小纰漏，但在偷漏税款这方面是没有问题的，当然合理避税还是有的。
+Guo Yi also checked the tax bureau's records, which confirmed his thoughts—the company's business activities were being conducted normally, and taxes were paid in full. Although some minor financial discrepancies had been found, there were no issues with tax evasion, though there was, of course, some legal tax avoidance.
 
-　　郭逸想了半天，没发现这事有什么群体性事件的潜质或者其他不和谐要素在内。不过，领导既然发话了，那就干脆去出差实地查询下好了，权当散心。
+Guo Yi thought for a long time but couldn't see any potential for a mass incident or other disharmonious elements in this matter. However, since his leader had spoken, he might as well take a business trip to investigate on-site. He could treat it as a short vacation.
 
-　　这个县城普普通通，象广东无数类似的沿海小城一样，这里的人口稠密经济繁荣。繁荣给这里带来了众多的流动人口。长途汽车站的广场上，每天都有拖家带口，背着大包小包的人群来来往往——寻找自己的梦想。
+***
 
-　　在这汹涌往复的人群中，半年来几乎每天都有真正的不速之客到来，他们装束各异，南腔北调，鬼鬼祟祟的拿着地图和纸条，或三五成群，或单独行动，在车站广场上东张西望的搜寻着什么。
+The county town was ordinary, like countless similar small coastal towns in Guangdong. It was densely populated and economically prosperous. Prosperity brought with it a large floating population. In the square of the long-distance bus station, crowds of people carrying their families and large bags came and went every day—searching for their dreams.
 
-　　[萧子山][y001]站在汽车站的出站口，手里举着个拆开的水果包装箱，歪歪扭扭的写着几个毛笔字“穿越贸易”。曾经白胖胖的脸孔瘦了许多也黑了许多，套着件汗渍斑驳的广告衫，一顶破了边的草帽。
+Among this surging crowd, for the past six months, almost every day, there were truly unexpected visitors. They were dressed differently, spoke with various accents, and furtively held maps and notes. They moved in small groups or alone, looking around the station square as if searching for something.
 
-　　曾经的外企白领，虽然失业了，如此模样地出现在一个沿海小城——连[萧子山][y001]自己都不知道自己是不是疯了，或是在做一个荒诞无比的梦——只不过这个梦的时间也太长了一点。而且，他知道越来越多的人也在追逐同一个梦。
+[Xiao Zishan][y001] stood at the exit of the bus station, holding up a piece of a dismantled fruit carton on which a few characters were scrawled with a brush: "Transmigration Trading." His once fair and plump face was much thinner and darker. He wore an ad-emblazoned T-shirt stained with sweat and a straw hat with a frayed brim.
 
-　　今天，照例又有一些人会到来，[萧子山][y001]知道，其中的一些人会像以往那样退缩和迟疑，也有些人则不会被选中。梦想的道路，将会是曲折的。
+A former white-collar worker in a foreign company, now unemployed, appearing like this in a small coastal town—even [Xiao Zishan][y001] himself didn't know if he was crazy or living in an absurdly long dream. And he knew that more and more people were chasing this same dream.
 
-　　郭逸从出站口出来，九月的天气依然有些燥热，太阳热辣辣的。他还是第一次来到这个小城，扫视了一下出站口的人群。他的目光马上注意到了那个拆开的纸箱。
+Today, as usual, some people would arrive. [Xiao Zishan][y001] knew that some of them would shrink back and hesitate, as others had before, and some would not be chosen. The road to a dream is always winding.
 
-　　“穿越贸易”。
+Guo Yi came out of the station exit. The September weather was still hot and dry, the sun scorching. It was his first time in this small town. He scanned the crowd at the exit. His gaze immediately fell on the dismantled cardboard box.
 
-　　这不就是[文德嗣][y002]开的公司么？就在这一瞬间，[萧子山][y001]和他的目光短暂的交集了，这电光火石的片刻，或许可以叫做“命定的相遇”——但是两人都没虎躯一震，散发出无尽的王八之气来让对方拜服。郭逸感兴趣的是这个公司，而[萧子山][y001]则意识到此人来者不善。
+"Transmigration Trading."
 
-　　[萧子山][y001]干了多年的销售，其他长进不大，察言观色看人的本事则学了不少。看此人目光敏锐有神，举手投足间显得自信从容，衣着低调却又干净利落，随身没带很多行李。这是个吃公家饭的人，十有八九在某些权力部门。此人在注意自己，当然，不是对他这个黑胖子有兴趣，而是自己举的那个包装箱。
+Wasn't that the company [Wen Desi][y002] had opened? In that instant, his eyes met [Xiao Zishan][y001]'s. That fleeting moment could perhaps be called a "fateful encounter"—but neither of them felt a jolt or emitted an overwhelming aura of power to make the other submit. Guo Yi was interested in the company, while [Xiao Zishan][y001] sensed that this man was not a friendly visitor.
 
-　　还没等他转过下一个念头，一个随身大包小包的又高又胖的小伙子已经迎面而来：
+Having worked in sales for many years, [Xiao Zishan][y001] hadn't improved much in other areas, but he had learned a lot about reading people. He saw that this man's gaze was sharp and spirited, his movements confident and calm. His clothes were low-key yet neat, and he carried little luggage. This was a man who worked for the government, most likely in some department with authority. The man was watching him—not because he was interested in a dark, chubby guy, but because of the sign he was holding.
 
-　　“穿越公司？”
+Before his next thought could form, a tall, fat young man laden with bags was already approaching him.
 
-　　“是啊，你是？”
+"Transmigration Company?"
 
-　　“我是来穿越的……”
+"Yes, and you are?"
 
-　　[萧子山][y001]瀑布汗：老大，你也不至于大庭广众地说出来吧，“嗯……这个……解放军席卷了哪里？”
+"I'm here to transmigrate..."
 
-　　来得人都得对下切口，这莫名其妙的规矩不知道是哪个想出来的，俺们又不是北方曲艺学校……大概是某人的黑话情结吧。
+[Xiao Zishan][y001] broke into a cold sweat. *Dude, you don't have to announce it in public!* "Um... right... where has the PLA swept through?"
 
-　　“亚洲，亚洲。”年轻人大概还沉浸在激动中，声音很大，“我是孟贤，孟贤啊！”
+Everyone who came had to exchange a countersign. He didn't know who came up with this ridiculous rule. *We're not a Northern performing arts school...* Probably someone's obsession with secret codes.
 
-　　“我知道，知道……”[萧子山][y001]的脑袋都冒汗了，他是个低调的人，做贼心虚般的压低了声音。“去停车场，有辆中巴，车号XXXXXX。”
+"Asia, Asia," the young man said loudly, probably still caught up in his excitement. "I'm Meng Xian, Meng Xian!"
 
-　　“[文总][y002]呢……”
+"I know, I know..." Sweat beaded on [Xiao Zishan][y001]'s head. He was a low-key person and, feeling guilty as a thief, lowered his voice. "Go to the parking lot. There's a minibus, license plate XXXXXX."
 
-　　“一会就能见到……我还得接几个人……”[萧子山][y001]胆战心惊的东张西望着，希望他们的对答没引人注意。
+"Where's [Director Wen][y002]..."
 
-　　四周熙熙攘攘的人都忙于自己的事情，没人注意他们。[萧子山][y001]稍稍定了下心，刚才那个人已经不见了，不知怎么的，他的心里有些暗暗的担心，回去要不要和执委会通报一下？
+"You'll see him in a bit... I still have to pick up a few more people..." [Xiao Zishan][y001] glanced around nervously, hoping their conversation hadn't attracted attention.
 
-　　那天郭逸却在一个角落里观察了他们很久。虽然他听不到他们在说什么，大致也知道这个拿着水果包装箱的人是在接站。一个人很激动，另外一个则显得不安，警觉，说明谈话的内容里有某些秘密。从接站人对周边环境的熟悉程度和包装箱上磨损来看，这样的接站活动已经持续了相当久。期间他尾随着兴致勃勃的孟贤到了停车场，记下了中巴的车牌。
+The bustling crowd around them was busy with their own affairs; no one paid them any mind. [Xiao Zishan][y001] calmed down a little. The man from before was gone. For some reason, a faint worry lingered in his heart. Should he report this to the Executive Committee when he got back?
 
-　　中巴没马上开走，说明还会有其他人来。但是郭逸决定不在这里奉陪了。他首先去电信和移动公司，调出了公司的通话记录，和他想像的相反，这公司的电话往来还相当的频繁，几乎每天都有大量的电话打进打出。
+That day, Guo Yi observed them from a corner for a long time. Although he couldn't hear what they were saying, he could tell that the man with the fruit box was picking people up. One person was very excited, while the other seemed uneasy and alert, indicating that their conversation contained some secret. From the pickup man's familiarity with the surroundings and the wear on the cardboard box, it was clear this activity had been going on for quite some time. He followed the enthusiastic Meng Xian to the parking lot and noted down the minibus's license plate.
 
-　　在当地有关部门的协助下，很快就查清了多数固话号码的属地：绝大多数是国内的一些中小企业、研究所、设计院，也有形形色色的贸易和咨询公司。五花八门，什么类型的企业都有。
+The minibus didn't leave immediately, which meant more people were coming. But Guo Yi decided not to wait. He first went to the telecom and mobile companies and pulled the company's call records. Contrary to what he expected, the company's phone traffic was quite frequent, with a large number of calls coming in and going out almost every day.
 
-　　手机则麻烦一些，手机放号比较随意，很多查不到所有者，号码分散的地域也太广泛了。郭逸便从固话那头着手调查。
+With the assistance of local authorities, he quickly traced the locations of most of the landline numbers. The vast majority belonged to small and medium-sized enterprises, research institutes, and design academies across the country, as well as various trading and consulting firms. They were a motley crew, covering all types of businesses.
 
-　　这一调查，让他感到极度的困惑。
+The mobile phones were more troublesome. Mobile numbers were assigned more randomly, and many owners couldn't be traced. The geographical distribution of the numbers was also too wide. So, Guo Yi started his investigation from the landline numbers.
 
-　　这家公司在频繁的向全国各地的企业、研究所、设计院进行联系，而且还采购了许多设备和物资，作为一家企业来说也没什么特殊之处——但是其购买的设备涉及的行业范围也未免太过广泛和怪异。订购发电机、小水电设备、变电设施这倒还能理解，奇怪的是又订购了多套风电系统，外加大量的备件。该公司还对各种图纸和技术资料表现出了极大的热忱，连安全套和卫生巾的制造技术都有兴趣。
+This investigation left him utterly bewildered.
 
-　　“他这么有钱？”郭逸不得不对其动机打个大大的问号，洗钱这个设想又一次浮现在脑海里。或者是在搞技术情报收集？从企业反馈的讯息看，他们感兴趣的不是什么高科技产品，恰恰相反，反而热衷于那些简单落后的过时技术和工艺。这世界上有这么当工业间谍的吗？
+The company was frequently contacting enterprises, research institutes, and design academies all over the country, and had also purchased a lot of equipment and materials. This wasn't unusual for a company—but the range of industries involved in its purchases was far too broad and bizarre. Ordering generators, small hydropower equipment, and substation facilities was understandable. What was strange was that they also ordered multiple wind power systems, plus a large number of spare parts. The company also showed great enthusiasm for all kinds of blueprints and technical data, even showing interest in the manufacturing technology for condoms and sanitary napkins.
 
-　　难道他们是在用这些作迷雾掩盖着某个重大的秘密？如果是这样，他们企图做什么呢？
+"Is he that rich?" Guo Yi had to seriously question their motives. The idea of money laundering once again surfaced in his mind. Or was it technical intelligence gathering? From the feedback from the enterprises, they weren't interested in high-tech products. On the contrary, they were keen on simple, backward, and outdated technologies and processes. Was this how industrial spies operated in this world?
 
-　　晚上，郭逸筋疲力尽地躺在酒店的床上，挂掉了N个要为他做减压按摩的电话，还有推荐做“根浴”的，并且表示这个是可以“明来”的。另有一个表示有“新来的小妹”——脑子里乱得像一锅粥，昏沉沉的睡着了。
+Could they be using all this as a smokescreen to cover up some major secret? If so, what were they trying to do?
 
-　　梦中，郭逸看到了[文德嗣][y002]，穿着件古怪的长衫。一艘巨大的船。乘风破浪，远处，是一个青翠的岛屿，蓝天白云，碧海银沙……
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+That night, Guo Yi lay exhausted on his hotel bed. He had hung up on numerous calls offering him stress-relieving massages, another recommending a "root bath," which they assured him was perfectly open and legal, and yet another mentioning a "newly arrived little sister." His mind was a chaotic mess, and he drifted into a groggy sleep.
+
+In his dream, Guo Yi saw [Wen Desi][y002], dressed in a strange long robe. A huge ship. It sailed through the wind and waves. In the distance was a lush green island, with a blue sky, white clouds, a turquoise sea, and silver sand...
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
