--- a/_posts/2009-11-1-2-01500.md
+++ b/_posts/2009-11-1-2-01500.md
@@ -1,140 +1,144 @@
 ---
 layout: post
-title: 第十五节 遇伏
+title: "Section 15: Ambushed"
 category: 2
 path: 2009-11-1-2-01500.md
 tag: [normal]
 ---
 
-　　“不用了吧，咱们谁跟谁呀，李哥对不？”
+"No need for that. We're all brothers here, right, Brother Li?"
 
-　　“少和我套这个近乎，”李军拿出片口香糖权当刷牙，避开了小魏贪婪的手，“你也是二十出头的人了，比我当年在机动中队当兵的时候还大两岁，该上岗却睡觉，在部队早挨班长的揍了，还好意思说？”
+"Don't get so familiar with me," Li Jun said, taking out a piece of chewing gum as a substitute for brushing his teeth and avoiding Little Wei's greedy hand. "You're in your early twenties, two years older than I was when I was a soldier in the mobile squadron. You were supposed to be on duty but you were sleeping. In the army, you would have been beaten by the squad leader long ago. How can you have the nerve to say that?"
 
-　　“情况不同，我们又不是部队……”
+"The situation is different. We're not the army..."
 
-　　“屁，执委会就是拿咱们当部队用呢，你不是对席亚洲、北炜说你最喜欢当兵打仗么，上岗的时候睡觉，嘿嘿……”
+"Bullshit. The Executive Committee is using us as an army. Didn't you tell Xi Yazhou and Bei Wei that you love being a soldier and fighting? Sleeping on duty, hehe..."
 
-　　“嘘，别说话，有情况！”北炜一摆手，两个人赶紧爬过来，蹲在坑边。
+"Shh, don't talk, there's a situation!" Bei Wei waved his hand, and the two of them quickly crawled over and squatted by the edge of the pit.
 
-　　晨雾渐渐消散，从城外的驿道上，陆陆续续有了行人，三三两两挑着担子，赶着猪牛鸡鸭，扶老携幼的往城里来。
+The morning mist gradually dissipated. Pedestrians began to appear on the post road outside the city, coming into the city in twos and threes, carrying loads on poles, driving pigs, cattle, chickens, and ducks, and supporting the old and young.
 
-　　“他们进城作啥，今天赶集？”魏爱文看到驿路上人络绎不绝的，觉得奇怪。
+"What are they going into the city for? Is it market day today?" Wei Aiwen found it strange to see the endless stream of people on the post road.
 
-　　“是难民，躲到城里去避难的。”
+"They are refugees, seeking shelter in the city."
 
-　　“难民，有小日本要来？”
+"Refugees? Are the Japanese coming?"
 
-　　北炜一时间很难理解小魏的思路：“日本人？哪来的日本人。”
+For a moment, Bei Wei had difficulty understanding Little Wei's train of thought. "The Japanese? Where would the Japanese come from?"
 
-　　“明朝不是天天闹倭寇么……”
+"Weren't there always Japanese pirates in the Ming Dynasty..."
 
-　　“这些人是躲我们的。”李运兴望着驿道上的破衣烂衫面目模糊的人群，心里微微发凉，我们和1628年的大明子民真得能沟通吗？
+"These people are fleeing from us," Li Yunxing said, looking at the crowd of ragged, indistinct figures on the post road. A chill went down his spine. *Can we really communicate with the people of the Ming Dynasty in 1628?*
 
-　　“我们又没干伤天害理的事情。”小魏的理解还是现代人方式的。
+"We haven't done anything wrong," Little Wei said, his understanding still that of a modern person.
 
-　　“说不定城里已经在传说我们是青面獠牙，吃小孩非礼老婆婆的非人类了……”
+"Maybe the rumors in the city are already saying that we are green-faced, tusked, non-human creatures that eat children and molest old women..."
 
-　　正说着话，忽然看到路上的百姓都往两旁躲闪，驿道上来了一群人，簇拥着三辆手推二轮车。为首的一个，头戴铁盔，身穿铠甲，腰带长刀，是个武官。
+As they were talking, they suddenly saw the common people on the road dodging to the sides. A group of people came up the post road, surrounding three two-wheeled handcarts. The one in the lead wore an iron helmet and armor, with a long saber at his waist. He was a military officer.
 
-　　“像是明军。”北炜一边说，一边默数着通过的人数，一、五、十……
+"They look like Ming soldiers," Bei Wei said as he silently counted the number of people passing by. One, five, ten...
 
-　　带头的不算，一共三十人，还有两辆手推车，因为夹杂在人群里，看不真切，不知道装得是什么，但是从推车的人数和姿势来看，车上的东西很重。
+Not counting the leader, there were thirty men in total, and two handcarts. Because they were mixed in with the crowd, he couldn't see clearly what was on them, but from the number of people pushing the carts and their posture, the things on the carts were very heavy.
 
-　　“是明军，都带着武器。”从望远镜里看，这群人还算行头整齐，但是除了三四个人之外无人着甲，状况好的有顶头盔。每人就是一根长枪。
+"They are Ming soldiers, all carrying weapons." Through the binoculars, the group looked neat and tidy, but except for three or four men, no one wore armor. The ones in better condition had helmets. Each man carried a long spear.
 
-　　手推车也看清楚了，第一辆上面安着一门铁炮，黑沉沉的看不清，不过估计也就是三磅炮的水平。后面的车上都是箱子、罐子之类，大约是弹药。
+The handcarts also became clear. The first one had an iron cannon mounted on it, dark and heavy, but he estimated it was at the level of a three-pounder. The cart behind it was loaded with boxes and jars, probably ammunition.
 
-　　“小魏，拍照！”
+"Little Wei, take pictures!"
 
-　　他魏爱文端起数码相机用长焦连续拍摄着，队伍、士兵、火炮、连带队军官和几个带甲兵士都拍了面部特写照片。
+Wei Aiwen raised his digital camera and took a series of shots with the telephoto lens, capturing the procession, the soldiers, the cannon, and even close-up photos of the leading officer and the few armored soldiers.
 
-　　“快看！”李运兴忽然失声叫了起来，声音大的把周围人都吓了一跳，“有个外国人！”
+"Look!" Li Yunxing suddenly cried out, his voice so loud it startled everyone around him. "There's a foreigner!"
 
-　　北炜调整观察方向。果然，在队伍的最后，是个蓬头垢面的外国人，一头棕色的头发十分醒目，他被人用绳子反绑着手连拖带拽的走着，光着脚，小腿上鲜血淋漓，身上披的是半件渔民的蓑衣，后面的一个小兵还不时那枪戳他的屁股催他快走。
+Bei Wei adjusted his direction of observation. Sure enough, at the end of the procession was a disheveled foreigner with conspicuous brown hair. His hands were tied behind his back with a rope, and he was being dragged along. He was barefoot, his calves were bleeding, and he was wearing half of a fisherman's straw cloak. A young soldier behind him kept prodding his buttocks with a spear to make him walk faster.
 
-　　商人？传教士？海盗？北炜的脑海中闪过一系列的问号。明代的广东福建沿海能看到外国人不稀罕，这个家伙怎么会给抓到临高县来了？是不是外国海盗？
+A merchant? A missionary? A pirate? A series of question marks flashed through Bei Wei's mind. It wasn't strange to see foreigners on the coast of Guangdong and Fujian in the Ming Dynasty, but how did this guy get captured and brought to Lingao County? Was he a foreign pirate?
 
-　　“给我叫通指挥部。”
+"Get me the command post."
 
-　　太阳初升的时候，明家一家和中美特工三人组已经聚集在营地门外的沙滩上，一脸茫然。
+***
 
-　　早晨起来吃过早餐之后，那个一直对他们胡说八道到了明代的[萧子山][y001]来了，受够了他的碎碎念的明家人还以为又来发神经了，没想到此人很客气的说决定放他们走了。
+As the sun was rising, the Ming family and the trio of Chinese-American agents were gathered on the beach outside the camp, looking bewildered.
 
-　　还没等反应过来，一艘交通艇就连人带行李的把他们都送上了岸。
+After waking up and having breakfast, [Xiao Zishan][y001], who had been spouting nonsense about them being in the Ming Dynasty, came over. The Ming family, who had had enough of his ramblings, thought he was having another fit, but unexpectedly, he very politely said that they had decided to let them go.
 
-　　海滩上的营地、港湾里的船只、沙滩上来回奔走的车辆和机械，扛着枪的士兵……这一切看起来是太不真实了，这群匪徒真是胆大包天啊。要不是这里有海湾，这家人还以为自己到了传说中的金三角地区。
+Before they could react, a transport boat had taken them and their luggage to the shore.
 
-　　“您看，行李都在这里了，都没动，您可以查点一下。”[萧子山][y001]笑容可掬的对还在发呆的一家人说。
+The camp on the beach, the ships in the harbor, the vehicles and machinery running back and forth on the sand, the soldiers carrying guns... all of it seemed so unreal. These bandits were truly audacious. If it weren't for the bay, the family would have thought they had ended up in the legendary Golden Triangle.
 
-　　明朗真弯腰去开行李的拉链，被他妈拦住了，笑着对[萧子山][y001]说：“信得过，信得过。”
+"You see, all the luggage is here, untouched. You can check it," [Xiao Zishan][y001] said with a beaming smile to the still-dazed family.
 
-　　“这是什么地方啊？把我们撂这也得说下在哪嘛。”漂亮的女警MM发话了。
+Ming Lang was about to bend down to open the zipper of his luggage but was stopped by his mother. She smiled at [Xiao Zishan][y001] and said, "We trust you, we trust you."
 
-　　老人家又赶紧拦下儿媳的话头：“不用，不用，小同志您就告诉我们往哪个方向走能上公路好了。这儿看起来太荒了，我们要走也得有个方向不是。”
+"Where is this place? You can't just drop us off without telling us where we are," the pretty policewoman spoke up.
 
-　　“大妈，我昨天不就和您说了吗，这里是临高县的博铺港，这河呢，是文澜江。公路是没有的，你们沿着河往上游走，不多远就是临高县城了——不过是明代的临高县城。”[萧子山][y001]说着这话都觉得自己在发神经。
+The old woman quickly interrupted her daughter-in-law. "No need, no need. Little comrade, just tell us which direction to walk to get to a main road. This place looks too desolate. We need a direction to walk, don't we?"
 
-　　老头子冷笑了一声：“格老子，博铺？你还不说这里是纽约。”
+"Ma'am, didn't I tell you yesterday? This is Bopu Port in Lingao County. This river is the Wenlan River. There are no highways. If you walk upstream along the river, it's not far to Lingao county town—but it's the Lingao county town of the Ming Dynasty." Even as [Xiao Zishan][y001] said this, he felt like he was going crazy himself.
 
-　　“您看，真没骗你们。”[萧子山][y001]反正昨天被骂惯了，他手一指烽火台，“那不就是临高的烽火台？那里过去就是临高角，老爷子您在海南当过兵，这地方您总该知道的。”
+The old man sneered, "My god, Bopu? You might as well say this is New York."
 
-　　“临高角？那灯塔呢？纪念碑乍不见了，给你吃了？”
+"You see, I'm really not lying to you." [Xiao Zishan][y001] was used to being cursed at yesterday. He pointed a finger at the beacon tower. "Isn't that the beacon tower of Lingao? And over there is Lingao Cape. Old sir, you served in the army in Hainan. You should know this place."
 
-　　（临高角上的两大标志性建筑：光绪年间建造的海关灯塔、解放海南登陆纪念碑。）
+"Lingao Cape? Then where's the lighthouse? Where did the monument disappear to? Did you eat it?"
 
-　　“这不是1628年吗，我们伟大的人民解放军还没来渡海解放海南。”
+(The two major landmarks on Lingao Cape: the customs lighthouse built during the Guangxu era, and the monument to the liberation of Hainan.)
 
-　　老爷子一脸不屑，还想说什么，被老妻推了一把，只好闭嘴了。
+"Isn't this 1628? Our great People's Liberation Army hasn't come to cross the sea and liberate Hainan yet."
 
-　　“博铺就博铺嘛，谢谢您了，我们这就走了。您请回吧。”大妈赶紧打着圆场。[萧子山][y001]笑了笑，直到郭逸他们也被带来了，才对他们说：
+The old man had a look of disdain and was about to say more, but his wife pushed him, and he had to shut up.
 
-　　“这是公安X处的郭同志，他正好陪二个外宾，你们一起走吧，路上有个照应。”
+"Bopu it is, then. Thank you. We'll be on our way now. Please go back," the old woman said, trying to smooth things over. [Xiao Zishan][y001] smiled, and only when Guo Yi and his group were also brought over did he say to them:
 
-　　明家的一家人都紧张起来，猜不透这[萧子山][y001]卖得是什么药。至于小郭他们，也对这一家有点莫名其妙，今天一早冉耀带着人把他们带下船，一路上他都以为这家伙要在半路上下毒手，开始以为会在甲板上被身后打黑枪，后来在交通艇上又做好了被种荷花的准备，到了海滩上以为面对行刑队壮烈牺牲，结果见到了老老少少的一家子，带着大大小小的箱子和行李包。
+"This is Comrade Guo from Section X of Public Security. He happens to be accompanying two foreign guests. You can all walk together and look out for each other."
 
-　　“小郭，你就和明老爷子一家一起走吧，沿河走就是临高县城。”[萧子山][y001]看着这两拨人，各自怀着不信任的目光彼此审视，心里不由得好笑，于鄂水这家伙可真够毒的。想到这群人在前往临高的道路上可能会遇到什么，又实在笑不出来，希望大家都平安无事吧。
+The Ming family became nervous, unable to guess what [Xiao Zishan][y001] was up to. As for Little Guo and his group, they were also a bit baffled by this family. This morning, Ran Yao had led people to take them off the ship. All along the way, he thought the guy was going to do something sinister. At first, he thought he would be shot in the back on the deck. Then, on the transport boat, he prepared to be dumped overboard. On the beach, he thought he would face a firing squad and die a heroic death. But instead, he saw a family of old and young, with large and small boxes and luggage bags.
 
-　　[萧子山][y001]看他们行李比较多，就叫了辆海滩上的农用车，把他们送到了河边。
+"Little Guo, you can go with Old Mr. Ming's family. Just follow the river, and you'll reach Lingao county town," [Xiao Zishan][y001] said, looking at the two groups, each eyeing the other with distrust. He couldn't help but find it amusing. That guy Yu E'shui was really vicious. But thinking about what this group might encounter on the road to Lingao, he couldn't really laugh. He hoped everyone would be safe.
 
-　　“就送你们到这里了，”他最后一次诚恳无比的说，“这是17世纪的海南……所以……”接着他就只看到七个人的背影正全速离开中。
+Seeing that they had a lot of luggage, [Xiao Zishan][y001] called over a farm truck from the beach and gave them a ride to the riverside.
 
-　　由于两拨人各怀心思，都以为对方是匪徒派来的，一开始是彼此默不作声，接着，明家的人就开始慢慢的落后了。
+"This is as far as we can take you," he said with utmost sincerity one last time. "This is Hainan in the 17th century... so..." Then he only saw the backs of the seven people leaving at full speed.
 
-　　“傻小子，走这么快干啥？”
+***
 
-　　“我不累啊……”明朗不明白妈是怎么了，虽然路不是很好走，但是好歹也是一路平地，自己一小伙，带个箱子走路还不算太累。
+Because the two groups had their own thoughts, each thinking the other was sent by the bandits, they were silent at first. Then, the Ming family began to slowly fall behind.
 
-　　她对前面的三个人撇了撇嘴：“慢点，我们行李多……”
+"Silly boy, why are you walking so fast?"
 
-　　明郎恍然大悟，原来妈的意思是和前面的人拉开距离，于是一家人便放慢了脚步，慢慢的落在了后面。
+"I'm not tired..." Ming Lang didn't understand what was wrong with his mother. Although the road was not easy to walk, it was at least flat ground. As a young man, carrying a suitcase was not too tiring.
 
-　　郭逸这伙行李不多，又都是执法人员，一开始步子就很快，看那一家人距离越落越远，心里反而有些高兴。他摸了摸失而复得的64手枪，虽然不是很能理解这伙匪徒的想法，但总算是已经脱离了他们的魔掌。现在所在地区不明，好在沿路走来，都有人类活动的痕迹——应该不是什么偏远不毛之地，走不了多久就该看到一二处有人烟的地方，有人烟就会有通讯工具，联络上组织就好办了。
+She pursed her lips towards the three people in front. "Slow down, we have a lot of luggage..."
 
-　　“老薛，你说这是怎么回事？”他心情轻松了许多，问走在一旁的薛子良，这个彪形大汉背着巨大的背包，走在乱石荒草间异常轻松。
+Ming Lang suddenly understood. His mother meant to put some distance between them and the people in front. So the family slowed down and gradually fell behind.
 
-　　“不知道。”ABC耸了下肩，“也许他们不愿意冒犯美国执法官员。”
+Guo Yi's group didn't have much luggage, and they were all law enforcement officers, so they walked quickly at first. Seeing the family falling further and further behind, he felt a little happy. He touched the Type 64 pistol that had been returned to him. Although he couldn't quite understand the motives of this group of bandits, he had at least escaped from their clutches. His current location was unknown, but fortunately, there were traces of human activity along the way—it shouldn't be some remote and barren land. It shouldn't be long before he saw a settlement. Where there were people, there would be communication tools. Once he contacted his organization, things would be easier.
 
-　　扯淡。郭逸想这美国佬真是不管肤色种族，二代人就都忘了本了，一脸妄自尊大的模样。
+"Old Xue, what do you think is going on?" he asked Xue Ziliang, who was walking beside him, his mood much lighter. The burly man was carrying a huge backpack and walked with unusual ease among the rocks and wild grass.
 
-　　“薛，你这话太没想法了。”
+"I don't know." The ABC shrugged. "Maybe they don't want to offend US law enforcement officers."
 
-　　“那又怎么办？我们可是连在哪里都不知道。对了，他说我们在什么临时？”
+*Bullshit.* Guo Yi thought this American really had forgotten his roots after two generations, regardless of skin color or race, with such an arrogant look.
 
-　　“是临高，海南省的一个县。”
+"Xue, that's a thoughtless thing to say."
 
-　　显然薛子良对海南没地理概念，居然问是不是中国的领土，差点晕过去的小郭只好稍微给他普及了一点中国地理。
+"Then what else can we do? We don't even know where we are. By the way, what did he say we were in? Lin-something?"
 
-　　“可是未必是真得，对吗？”薛子良说。
+"It's Lingao, a county in Hainan Province."
 
-　　“嗯，我相信要是真在临高，这么大的动静派出所早过来了，手机也不会没信号。”
+Apparently, Xue Ziliang had no geographical concept of Hainan and even asked if it was Chinese territory. Little Guo, who almost fainted, had to give him a little lesson in Chinese geography.
 
-　　“那不就是了，郭，”薛子良一面走路，一面说，“我们连周围的基本情况都不知道，拿什么推测？还是赶快到有人的地方。”
+"But it might not be true, right?" Xue Ziliang said.
 
-　　地势慢慢的高了起来，虽然不是很明显。他们此时正在上坡。土地被开发过，到处留下了人类活动的痕迹，河畔不时可以看到被开垦过的小片水田，河边挖开的引水渠道……除此之外，就是无边无际的荒烟蔓草，有的地方草甚至长到一人多高。路上很少见高大的树木，只有些杂木林和灌木丛，河水流淌着，看起来很清澈，
+"Well, I believe if we were really in Lingao, the police station would have been here long ago with such a big commotion, and our mobile phones wouldn't have no signal."
 
-　　“我们休息一会吧。”这时远处传来了隆隆的水声，薛子良提议道，“萨琳娜说她身体有些不大舒服。”
+"There you have it, Guo," Xue Ziliang said as he walked. "We don't even know the basic situation around us. What can we infer? Let's hurry up and get to a place with people."
 
-　　“是吗？不会着凉了吧？”郭逸说着，一屁股坐了下来，从怀里掏出了64手枪——他急于要检查一下枪枝的情况，匪徒会把手枪还给他有点意外，不管他们的动机如何，总让他少了许多麻烦——丢失枪枝可是很大的问题。
+The terrain slowly rose, though not obviously. They were now going uphill. The land had been developed, and traces of human activity were everywhere. Small paddy fields could be seen from time to time by the river, with irrigation channels dug from the river... Besides that, there was just endless desolate wilderness, with grass growing as tall as a person in some places. There were few tall trees on the road, only some miscellaneous woods and bushes. The river flowed by, looking very clear.
 
-　　“不，不会。”薛子良刚想说什么。草丛中猛得响起了急促的锣声，三个人都是一怔，接着十几枝羽箭便纷纷从草丛和树林中射了出来！
+"Let's rest for a while." At this time, the rumbling sound of water could be heard in the distance. Xue Ziliang suggested, "Sarlina said she's not feeling well."
+
+"Is that so? Did she catch a cold?" Guo Yi said, sitting down with a plop and taking out his Type 64 pistol from his pocket. He was anxious to check the condition of the gun. It was a bit surprising that the bandits would return his pistol. Whatever their motives, it saved him a lot of trouble—losing a gun was a big problem.
+
+"No, she wouldn't." Xue Ziliang was about to say something when a rapid gong sound suddenly came from the grass. The three of them were startled, and then a dozen or so feathered arrows shot out from the grass and woods!
 [y001]: /characters/y001 "萧子山"
