--- a/_posts/2009-11-11-2-02500.md
+++ b/_posts/2009-11-11-2-02500.md
@@ -1,111 +1,111 @@
 ---
 layout: post
-title: 第二十五节 邬德的新任务（三）
+title: Section 25: Wu De's New Task (Part 3)
 category: 2
 path: 2009-11-11-2-02500.md
 tag: [normal]
 ---
 
-　　邬德吃完海鲜饭，又给保温杯灌满水，带上装备，邬德继续他的执勤警戒任务去了。今天的任务地点是筑路工地的3号标段，昨晚听任务分配的时候就知道今天执委会领导要来工地劳动，所以警卫人员加倍。据说这是贯彻执委会“人人参加劳动，避免干部特殊化”的文件精神的新举措。
+After finishing his seafood rice, Wu De filled his thermos with water, put on his gear, and went on with his guard duty. Today's mission location was Section 3 of the road construction site. When he heard the mission assignment last night, he knew that the leaders of the Executive Committee would be coming to the construction site to work today, so the number of guards was doubled. It was said that this was a new measure to implement the spirit of the Executive Committee's document "everyone participates in labor to avoid cadre specialization."
 
-　　不费多大力，他就找到了干部的工作地点——想找不到都难，因为丁丁这个无孔不入的家伙已经爬在推土机上，一面指挥大家摆pose，一面大呼小叫的叫他的洋马女朋友拍照。[马千瞩][y005]和几个执委带着僵硬的微笑，拿着个折叠工兵铲作挖土状。
+Without much effort, he found the cadres' work location—it was hard not to find it, because Ding Ding, that omnipresent fellow, had already climbed onto a bulldozer, directing everyone to pose on one hand, and shouting for his foreign girlfriend to take pictures on the other. [Ma Qianzhu][y005] and a few other executive committee members, with stiff smiles, held folding entrenching tools and pretended to be digging.
 
-　　靠，这画面好熟悉啊。
+Damn, this scene is so familiar.
 
-　　待到记者散去，执委们倒还在埋头挖土运土的，没有立马上车走人，也没搞什么握手慰问劳模之类的事情。看来小丁的业务还不够熟练。
+After the reporters dispersed, the executive committee members were still busy digging and transporting earth. They didn't immediately get in the car and leave, nor did they do things like shaking hands and comforting the model workers. It seemed that Little Ding's business was not yet proficient enough.
 
-　　“哎，挖坑准备埋谁呢？”邬德走过去调侃道。
+"Hey, who are you digging a pit to bury?" Wu De walked over and teased.
 
-　　“当然是埋你这种闲人咯，老子在修路啊。”老马没好气的回应。
+"Of course, to bury an idler like you. I'm building a road," Old Ma replied irritably.
 
-　　“修路？我咋看你像挖坑呢。”
+"Building a road? Why do I see you digging a pit?"
 
-　　“挖坑？我很有公德心的，不像某些人。”[马千瞩][y005]挥了一铲子，对着那边也在干活的叶孟言吼了一声，“干啥呢？我们是取土，你挖那么深的坑做什么？害人啊！”
+"Digging a pit? I have a strong sense of public morality, unlike some people." [Ma Qianzhu][y005] swung his shovel and shouted at Ye Mengyan, who was also working over there, "What are you doing? We are taking earth, why are you digging such a deep pit? You're going to hurt someone!"
 
-　　“哈哈……哦，对了，你手里的家伙那是骗那些前世没干过农活的娃娃们的，我这有把二齿开山锄，装个柄就好用，那才是干活用的。”邬德停止了玩笑，指着老马手里的铲子说。
+"Haha... Oh, by the way, the thing in your hand is for fooling those kids who have never done farm work in their previous lives. I have a two-pronged mountain hoe here. Just put a handle on it and it's good to use. That's what's for work." Wu De stopped joking and pointed at the shovel in Old Ma's hand.
 
-　　“还不快去拿？没眼力见的……”[马千瞩][y005]停下活计，举起铲子作虚劈状。
+"Why don't you go get it? You have no foresight..." [Ma Qianzhu][y005] stopped his work and raised his shovel in a mock-chopping motion.
 
-　　邬德于是又回到窝棚里，把锄头、铲子、镐头、篾刀、斧头一股脑的拿了出来——这些都是他带来的工具，自己用过的比较称手。他选上几根合适的树杆，给工具都装上柄，打上木楔，在一个树墩上磕结实，取了一把锄头带回工地给[马千瞩][y005]。
+So Wu De went back to the shed and took out all the hoes, shovels, picks, bamboo knives, and axes—these were all tools he had brought with him, and he was used to using them. He selected a few suitable tree branches, fitted handles to the tools, drove in wooden wedges, and knocked them firmly on a tree stump. He took a hoe and brought it back to the construction site for [Ma Qianzhu][y005].
 
-　　[马千瞩][y005]接过锄头，呸呸的往掌心里吐口唾沫，伦圆了锄头就刨了下去，一看这把势，邬德连连摇头。
+[Ma Qianzhu][y005] took the hoe, spat on his palms, swung the hoe in a circle, and began to dig. Seeing this posture, Wu De shook his head repeatedly.
 
-　　果然，[马千瞩][y005]锄了没几下，锄头就脱落了……而他自己捏着锄头柄仰面倒在坑里。
+Sure enough, after [Ma Qianzhu][y005] had hoed a few times, the hoe head fell off... and he himself fell backward into the pit, holding the hoe handle.
 
-　　“哦哈哈哈……这个民工是假冒的嘛。来来来，暂住证办了没，拿出来看看……”看着[马千瞩][y005]的狼狈样，他忍不住又调侃起起来。
+"Oh hahaha... this migrant worker is a fake. Come, come, have you got your temporary residence permit? Let me see it..." Seeing [Ma Qianzhu][y005]'s sorry state, he couldn't help but tease him again.
 
-　　“扯啥淡呢，快拉我起来……”
+"What are you talking about? Pull me up quickly..."
 
-　　“好好，不开玩笑了……”见马委员真火了，赶紧倒嘴。
+"Okay, okay, no more jokes..." Seeing that Committee Member Ma was really angry, he quickly changed his tune.
 
-　　他跳下坑，帮[马千瞩][y005]把锄头装好，教他如何使用这种千年来基本没进化过的工具来。
+He jumped into the pit, helped [Ma Qianzhu][y005] fix the hoe, and taught him how to use this tool that had barely evolved in a thousand years.
 
-　　“哎，昨天你吃什么？”一边拿着洋锹把[马千瞩][y005]刨下的土铲到坑外，一边问道。执行警戒顺便干点活，免得在领导面前显得太悠闲。
+"Hey, what did you eat yesterday?" he asked while shoveling the earth dug by [Ma Qianzhu][y005] out of the pit with a foreign shovel. He was on guard duty and did some work on the side to avoid looking too idle in front of the leader.
 
-　　“别提了，干粮和海带汤，你呢？好像食堂领饭没见你。”
+"Don't mention it, dry rations and kelp soup. What about you? I didn't see you at the canteen for meals."
 
-　　“我吃海鲜什锦饭，那味道……小魏没回来，他蹲临高城下都快四天了吧？”
+"I had seafood paella. The taste... Little Wei hasn't come back. He's been squatting under Lingao city for almost four days, right?"
 
-　　“他乐意呗。都换过二批人了，还蹲那里，今天大概要回来了。海鲜饭？说说嘛。”[马千瞩][y005]对海鲜饭来了兴趣。
+"He's happy to do it. They've already changed two batches of people, and he's still squatting there. He'll probably be back today. Seafood paella? Tell me about it." [Ma Qianzhu][y005] became interested in seafood paella.
 
-　　“靠山吃山，靠海吃海，这几天我都捉些鱼蟹，摸点贝壳，凑合着就烧来吃了，怎么，想搭伙吗？想的话，自己带点米过来。”邬德说道。
+"Live off the land if you're near the mountains, live off the sea if you're near the sea. These past few days, I've been catching some fish and crabs, and gathering some shellfish, and just cooking them to eat. What, you want to join me? If you want, bring your own rice," Wu De said.
 
-　　“我也想啊，不过海滩上的事情都处理不完，不是个个都像你这样逍遥，对了，执委会给你新任务了。”
+"I want to, but I can't finish the things on the beach. Not everyone is as carefree as you. By the way, the Executive Committee has a new task for you."
 
-　　“新任务？”邬德一愣，难道他在伙房帮忙做饭的事情让执委会知道了，要调他去当伙头军？
+"A new task?" Wu De was stunned. Could it be that the Executive Committee knew about him helping out in the kitchen and wanted to transfer him to be a cook?
 
-　　五个俘虏原以为当探子被抓是必死无疑，纵然海盗们愿意留他们以钱赎命，他们都是贫民佃户人家，老母固然没有八十，八岁幼子也根本谈不上——都是光棍一条。贪图些赏钱才来当探子的，再要赎人哪里拿得出钱来。一个个都在关押的窝棚里流泪号哭。
+The five captives had originally thought that being caught as spies was a certain death sentence. Even if the pirates were willing to let them be ransomed for money, they were all poor tenant farmers. They certainly didn't have an eighty-year-old mother, and they couldn't even talk about an eight-year-old son—they were all single. They had come to be spies for the sake of some reward money. Where would they get the money to be ransomed? They were all crying and wailing in the shed where they were being held.
 
-　　正哭着，都给人赶了出来，眼看几天来一直审问他们的那个小头目趾高气扬地走了过来，一身从来没见过的锁子甲在阳光下闪闪发亮，边上还有几个身材高大的头目，几个人赶紧跪下。
+As they were crying, they were all driven out. They saw the little leader who had been interrogating them for the past few days walking over arrogantly, wearing a suit of chain mail they had never seen before, shining in the sun. There were also a few tall leaders beside him. The few of them quickly knelt down.
 
-　　“都起来，都起来，站成一排。”负责看守的小海贼拿着细棍子抽着他们。
+"Get up, all of you, stand in a line." The little pirate in charge of guarding them whipped them with a thin stick.
 
-　　邬德扫视了面前的五个人一眼，个个又黑又瘦，古代劳动人民显然普遍缺少营养，一幅发育不良的样子。就说旁边那拿棍子的看守袁秋实，才不过18岁，个头体格都比他们大一圈。现代小孩就是发育的好。
+Wu De glanced at the five people in front of him. They were all dark and thin. The ancient working people were obviously generally malnourished and looked underdeveloped. Take the guard Yuan Qiushi with the stick next to him, for example. He was only 18 years old, but he was a head taller and a circle bigger than them. Modern children just develop well.
 
-　　既然要把他们留下来，就得摸索出一套人员管理模式。虽然面对的是明代的土人，但是人的本性千百年来并没有太多变化。对这些抓来的俘虏，首先就要让他们“知畏”，打消一切反抗的念头。无论是新兵队班长的咆哮，还是监狱里的号长的下马威，都是一样的效果。
+Since they were going to be kept, a personnel management model had to be explored. Although they were facing the natives of the Ming Dynasty, human nature had not changed much over thousands of years. For these captured prisoners, the first thing was to make them "know fear" and dispel all thoughts of resistance. Whether it was the roar of the new recruit squad leader or the show of force from the prison boss, the effect was the same.
 
-　　他铁板着脸，面无表情的审视着这几个人，身边的熊卜佑穿着自制的锁子甲手持从[文总][y002]那里借来的长刀，不时有意无意的恶狠狠的挥舞着。看得这五个人腿肚子直发抖，有人忽然很想拉屎。
+He put on a stern face and expressionlessly examined these few people. Xiong Buyou beside him, wearing self-made chain mail and holding a long sword borrowed from [Wen Zong][y002], brandished it fiercely from time to time, intentionally or unintentionally. The five people's legs were trembling, and someone suddenly felt the urge to defecate.
 
-　　接着又看到来了一个全身穿白的海贼，虽然一脸斯文，一身白色长衫，透着股邪气，看起来有点象出殡的时候的白无常，这人眼睛贼溜溜的在自己全身看来看去。几个人更是连气都不敢大出了。
+Then they saw another pirate dressed all in white coming over. Although he had a scholarly face and was dressed in a long white robe, he exuded an evil aura, looking a bit like the White Impermanence at a funeral. This person's eyes were darting around, looking at their whole bodies. The few of them didn't even dare to breathe loudly.
 
-　　“脱光衣服！”邬德大声的吼了一声。他的普通话俘虏们听不懂，一个个不知道干啥地盯着他的嘴巴看。
+"Take off your clothes!" Wu De shouted loudly. The captives couldn't understand his Mandarin and stared at his mouth, not knowing what to do.
 
-　　熊卜佑刚想翻译，邬德冲着他摇摇头，又对小袁一摆头，这小伙子劈头盖脸的拿着棍子一顿乱打，打的几个人抱头乱滚。
+Xiong Buyou was about to translate when Wu De shook his head at him and then nodded at Little Yuan. This young man beat them with a stick, and the few of them rolled around holding their heads.
 
-　　邬德又是一摆手，几个人又在小袁的棍子驱赶下站成一排。
+Wu De waved his hand again, and the few of them were driven by Little Yuan's stick to stand in a line again.
 
-　　“脱光衣服！”
+"Take off your clothes!"
 
-　　这次的命令加了手势，指着他们身上的破衣烂衫。机灵点的明白了，这是要他们脱衣服，不过这破衣烂衫也不值钱啊，这伙海贼哪个都穿得比他们好。正迟疑间，小袁的棍子又劈头盖脑的打了下来，这下立刻全把衣服脱得精光，一个个瑟瑟发抖。
+This time, the command was accompanied by a gesture, pointing at their tattered clothes. The smarter ones understood that they were being told to take off their clothes, but these tattered clothes were not worth much. All of these pirates were dressed better than them. While they were hesitating, Little Yuan's stick came down on them again. This time, they immediately stripped naked, shivering.
 
-　　“河大夫，你检查吧。”
+"Dr. He, you can examine them."
 
-　　既然要把人留下当劳工，以后就会有许多和穿越众接触的机会，搞好他们的卫生也就是维护穿越者自己的健康。
+Since they were going to be kept as laborers, they would have many opportunities to come into contact with the transmigrators in the future. Taking care of their hygiene was also to protect the health of the transmigrators themselves.
 
-　　河马负责给这些人体检，虽然还没有动手，凭他的经验也知道，这些人主要是寄生虫、皮肤感染之类。没有清洁的衣服、很少能够洗澡、住宅环境恶劣、人畜杂居，这样出现这样的情况不足为奇。
+He Ma was in charge of giving these people a physical examination. Although he hadn't started yet, he knew from his experience that these people mainly had parasites, skin infections, and the like. Without clean clothes, rarely being able to take a bath, poor housing conditions, and living with livestock, it was not surprising that such a situation occurred.
 
-　　再接着邬德的口令和袁秋实的棍子下，几个可怜的人终于明白要把自己的屁股撅起来，还得掰开着把ju花暴露出来，这群海贼难道要菊暴么？自己长得可一点都不像老爷们身边的小僮仆那么雪白粉嫩啊，这几位海贼虽然个个威猛，但是在光天化日之下集体菊暴，他们的口味还真好……
+Then, under Wu De's command and Yuan Qiushi's stick, the few poor people finally understood that they had to stick out their buttocks and even spread them to expose their anuses. Were these pirates going to rape them anally? They didn't look as fair and tender as the young servants around the masters. Although these pirates were all mighty, their taste was really good to have a group anal rape in broad daylight...
 
-　　河马戴上口罩和乳胶手套，看这五个扒开的屁股里面有明显的肠道寄生虫的卵，尽管已经做了充分的心理准备，他还是产生了呕吐的感觉。
+He Ma put on a mask and latex gloves. He saw obvious eggs of intestinal parasites in the five spread buttocks. Although he had made full psychological preparations, he still felt the urge to vomit.
 
-　　所有俘虏身上都有许多疮疤，皮肤上有跳蚤、臭虫之类的寄生虫叮咬过的痕迹。不过没有什么大毛病。他检查了这些人的头发，不出所料有许多的头蚤、虮子，出乎意料的是他还发现了有二个人头皮上还牢牢的吸附着蜱。这东西在他们来的那个时代已经很少见了，只有在比较荒僻的野外还能遇到。
+All the captives had many sores on their bodies, and there were traces of bites from parasites such as fleas and bedbugs on their skin. But there were no major problems. He examined their hair and, as expected, found many head lice and nits. To his surprise, he also found that two of them had ticks firmly attached to their scalps. This thing was already rare in the era they came from, and could only be encountered in relatively remote wilderness.
 
-　　又检查了所有人的牙齿，都有牙结石和营养不良造成的蓝线，但没有龋齿——估计他们也没有机会得龋齿。河马原来担心他们有麻风或者梅毒这样的恶性疾病，但是看起来这些人都很健康。
+He also examined everyone's teeth. They all had tartar and blue lines caused by malnutrition, but no cavities—it was estimated that they had no chance of getting cavities. He Ma was originally worried that they might have malignant diseases such as leprosy or syphilis, but it seemed that these people were all very healthy.
 
-　　“让他们洗澡吧。”河马说，“看起来没什么大碍。很健康。”
+"Let them take a bath," He Ma said. "It seems there's nothing serious. They are very healthy."
 
-　　“就在河里？”邬德问，“不会感染血吸虫吧？”
+"In the river?" Wu De asked. "Won't they get schistosomiasis?"
 
-　　“不会，我查过临高的医疗卫生志，从来没提过有这个病。另外这里的水源里也没发现过钉螺。”
+"No, I've checked the medical and health records of Lingao, and there's no mention of this disease. Besides, no snails have been found in the water source here."
 
-　　“下河洗澡！”邬德的这个命令却引起了一阵小骚动，几个俘虏还以为是要把他们赶到河里淹死，任小袁棍子乱抽，就是不动，熊卜佑挥舞着钢刀才把他们都给逼下水去。其实水并不深，邬德特意选了一个很浅的河湾。几个可怜人在棍子和刀光的威逼下在水里打滚，不时还得全身没入水中。直到憋不住了才冒出来。
+"Get in the river and take a bath!" Wu De's command caused a small commotion. The few captives thought they were going to be driven into the river to be drowned. They wouldn't move, no matter how Little Yuan beat them with his stick. Xiong Buyou had to brandish his steel sword to force them all into the water. In fact, the water was not deep. Wu De had deliberately chosen a very shallow river bay. The few poor people rolled around in the water under the threat of sticks and swords, and from time to time they had to be completely submerged. They only came up when they couldn't hold their breath any longer.
 
-　　河马在河滩上架起了从路上跑空的民房里找到的一口锅，把衣服都给煮洗了一遍——简单的话直接丢火里烧了最好，但是眼下穿越者没有多少服装储备可以给当地劳工——纺织工业还只是在纸面上。
+He Ma set up a pot he had found in an empty house on the road on the river beach and boiled all their clothes—to put it simply, it would be best to throw them directly into the fire, but at the moment, the transmigrators did not have much clothing reserves for the local laborers—the textile industry was still only on paper.
 
-　　终于被许可上岸的人，又被拉到在一块石头上，这次轮到了杨宝贵的老婆上阵，五个俘虏眼看又来一个女海贼，一身白衣，脸上蒙得严严实实，手里拿着锋利的刀子，不由得魂飞魄散，都把手按住了自己的下体。有个人还马上跪爬到邬德脚下连连磕头，说他三代单传，要他干什么都可以，唯独太监是不当的。
+The people who were finally allowed to go ashore were pulled to a rock again. This time, it was Yang Baogui's wife's turn. The five captives saw another female pirate coming, dressed in white, her face tightly covered, and holding a sharp knife in her hand. They were scared out of their wits and all covered their lower bodies with their hands. One of them even immediately knelt and crawled to Wu De's feet, kowtowing repeatedly, saying that he was the only son for three generations and would do whatever he was told, but he would not be a eunuch.
 
-　　护士虽然不会剃头，给手术病人剃毛的经验可是足够的。手里的剪刀剃刀一阵飞舞，顷刻五个人的脑袋就被剃成了秃瓢。
+Although the nurse couldn't cut hair, she had enough experience in shaving patients for surgery. The scissors and razor in her hand flew around, and in an instant, the five people's heads were shaved bald.
 
-　　乡下人虽然没有身体发肤受诸父母之类的熏陶，但是突然被剃光了头发，还是觉得又惊又惧，有人放声大哭起来，声音极其凄惨，连河马都觉得有点不忍心了。
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
+Although the country people had not been indoctrinated with the idea that their bodies, hair, and skin were received from their parents, they were still shocked and frightened when their hair was suddenly shaved off. Someone burst into tears, and the sound was extremely miserable. Even He Ma felt a little unbearable.
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma Qianzhu"
