--- a/_posts/2009-11-12-2-02600.md
+++ b/_posts/2009-11-12-2-02600.md
@@ -1,109 +1,109 @@
 ---
 layout: post
-title: 第二十六节 邬德的新任务（四）
+title: Section 26: Wu De's New Task (Part 4)
 category: 2
 path: 2009-11-12-2-02600.md
 tag: [normal]
 ---
 
-　　“阿德，这是不是有点过了？”
+"Ah De, isn't this a bit too much?"
 
-　　“你们这些人，说起来话来一个比一个狠，动不动要屠日灭美的，见人哭几声就不行了？”邬德冷着脸，对着袁秋实说，“谁哭就狠狠的揍，揍到不哭为止。”
+"You people, you talk tougher than anyone else, always wanting to slaughter Japan and destroy the US, but you can't stand it when you see someone cry a few times?" Wu De said with a cold face to Yuan Qiushi, "Whoever cries, beat them hard until they stop crying."
 
-　　小袁果然年纪轻，下得了手，棍子劈里啪啦的下去。熊卜佑吼着：“不许哭，都给我站好了！”
+Little Yuan was indeed young and ruthless. The stick came down with a crackle. Xiong Buyou roared, "No crying, all of you stand up straight!"
 
-　　邬德知道这五个人连佃户长工这样的级别都混不上，属于旧中国农村里最低级的短工，一个佃户还有房屋，有一点虽然不是自己的总算还能有点收成的土地；长工起码也有个棚子栖身，粗粮管饱。这些人真所谓是上无寸瓦下无一垄，吃了这顿没下顿的穷苦人。他心中浮起一丝同情，但是，他很快就将这同情抹去，同情对穿越者来说是奢侈的感情，他们来到了一个不属于他们的时空，一切的一切都要用他人的血肉去铺垫，奴役几个人又算得了什么。更何况这些人将来如果能活下来看到穿越大业成功的日子，多半还要吹嘘自己从龙最早，子孙后代都要为祖宗这段当奴隶的日子而自豪，说不定还会著述立说上电视签名售书，讴歌穿越众是历史发展的必然趋势，至于会不会被人抽耳光就很难说了。
+Wu De knew that these five people couldn't even be considered tenant farmers or long-term laborers. They belonged to the lowest level of short-term laborers in old China's rural areas. A tenant farmer still had a house and a piece of land that, although not his own, could still yield some harvest. A long-term laborer at least had a shed to live in and was provided with coarse grains. These people were truly the poor who had nothing to their names and didn't know where their next meal would come from. A trace of sympathy rose in his heart, but he quickly erased it. Sympathy was a luxury for the transmigrators. They had come to a time and space that did not belong to them, and everything had to be paved with the flesh and blood of others. What was enslaving a few people? Moreover, if these people could survive to see the success of the great cause of transmigration, they would probably boast about being the earliest followers of the dragon. Their descendants would be proud of their ancestors' days as slaves, and might even write books, appear on TV, and sign autographs, praising the transmigrators as the inevitable trend of historical development. As for whether they would be slapped in the face, it was hard to say.
 
-　　俘虏们经过刚才的一番棍棒相交已经服服帖帖，一个个低眉垂眼，不敢抬起头。每个人都清楚，这位便是管他们的头目了。看样子暂时是不会要他们的小命，那么今后日子便取决于这个头目的个人好恶了。这些海贼，连官府的王法都不怕，何况几个小民，杀个人不等于捏死个苍蝇。
+After the beating, the captives were submissive, with their heads bowed and their eyes downcast, not daring to look up. Everyone knew that this was the leader in charge of them. It seemed that he would not take their lives for the time being, so their future days would depend on this leader's personal likes and dislikes. These sea pirates were not even afraid of the government's laws, let alone a few commoners. Killing a person was no different from crushing a fly.
 
-　　“今日第一次见面。从前往后，你们就是我穿越众的人了。”邬德提高嗓音，“我说什么就得去做什么！好好干活，二餐一衣总少不了你们。否则……”他冷哼了一声，“从明天起，这位熊头目不会再在一旁帮你们传话，我说话，你们听不懂一次，二次，我可原谅，第三次还听不明白，立刻拉出去砍了！这等废物，留着做什么？！”他说得声色厉疾，熊卜佑也声嘶力竭的吼叫着，大概想准确的传达他的精神。
+"This is our first meeting. From now on, you are my transmigrators' people." Wu De raised his voice, "You must do whatever I say! Work hard, and you will not lack for two meals and one set of clothes. Otherwise..." He snorted coldly, "From tomorrow on, this Leader Xiong will no longer be here to translate for you. When I speak, if you don't understand once, or twice, I can forgive you. If you still don't understand the third time, you will be immediately taken out and beheaded! What's the use of keeping such useless people?!" He spoke with a stern voice and a fierce expression. Xiong Buyou also roared at the top of his lungs, probably trying to accurately convey his spirit.
 
-　　语言沟通是穿越众和当地劳工的最大障碍，邬德当然不可能时时刻刻把团队里唯一的翻译带在身边，论到快速学习的效果，严厉粗暴比循循善诱更有效。
+Language communication was the biggest obstacle between the transmigrators and the local laborers. Of course, Wu De could not always have the only translator in the team with him. In terms of the effect of rapid learning, severity and brutality were more effective than patient guidance.
 
-　　俘虏们的脸上都露出了不安的神情，但是在他目光一扫之下，都把脑袋垂了下去。
+The captives' faces all showed unease, but when his eyes swept over them, they all lowered their heads.
 
-　　河马在旁边小声说：“这样老是杀人来威胁不好吧？万一学不会咋办，真杀人？”
+He Ma whispered from the side, "Isn't it bad to always threaten to kill people like this? What if they can't learn? Will you really kill them?"
 
-　　邬德对他不满意地看了一眼，冷笑道：“那就杀呗。”
+Wu De gave him a dissatisfied look and sneered, "Then we'll kill them."
 
-　　河马的脖子忽然有点发冷，他深知人的暴虐本性在没有制约的环境下会放大到什么样的程度。
+He Ma's neck suddenly felt a little cold. He knew very well to what extent human brutality could be amplified in an environment without constraints.
 
-　　“现在点名，叫到名字的要应一声‘到’！这是你们要记住的第一个规矩，一点不到抽四十藤条，二点不到抽八十，三点不到抽二百。”
+"Now, roll call. When your name is called, you must answer 'Here!' This is the first rule you must remember. If you are not here at the first call, you will receive forty lashes with a rattan cane. If you are not here at the second call, you will receive eighty lashes. If you are not here at the third call, you will receive two hundred lashes."
 
-　　“王田！”对着名单，邬德叫了第一个名字。
+"Wang Tian!" Wu De called the first name from the list.
 
-　　“啊？”回应的是个矮个子，估计也就一米五十左右，看年龄大概二十出头。
+"Huh?" The one who responded was a short man, probably only about 1.5 meters tall, and in his early twenties.
 
-　　“说‘到’！”小袁配合默契，笞棍已经抽了下来。
+"Say 'Here'!" Little Yuan cooperated tacitly, and the whip had already come down.
 
-　　被棍棒纠正过来的王田赶紧纠正了自己的错误。
+Wang Tian, who had been corrected by the stick, quickly corrected his mistake.
 
-　　“林兴！”
+"Lin Xing!"
 
-　　应声的人声音很大，语音却还是听不明白，这个人看起来高大些，身材也比较健壮，虽然头低着，但是邬德还是从他身上看到了一丝不驯。
+The person who answered had a loud voice, but his pronunciation was still incomprehensible. This person looked taller and more robust. Although his head was bowed, Wu De could still see a trace of rebelliousness in him.
 
-　　“我听不懂。”邬德决心打掉他最后的一点不驯，一挥手，又是一顿乱棍，直到他比较正确地喊出了“到”。
+"I don't understand." Wu De was determined to beat the last bit of rebelliousness out of him. With a wave of his hand, another round of beatings followed until he could shout "Here" more correctly.
 
-　　榜样的力量是无穷的——接下来的三个人都能比较准确地喊出这个“到”字了。基本有点样子之后，就由邬德带队去上工，他即当警卫又监工，两不误事。工地上其实也不少这几个人干活。
+The power of example is infinite—the next three people could all shout the word "Here" more accurately. After they basically got the hang of it, Wu De led the team to work. He acted as both a guard and a supervisor, without neglecting either. There were actually quite a few people working on the construction site.
 
-　　他有意把这些人安排在离机械稍近一些的地方，在这么近的距离内看工程机械干活即使是现代人也会觉得很震撼，何况几个从没出过县界的土人。当发现穿越者拥有的不仅是他们这些草民，更是任何人都无法反抗的巨大力量，他们就会变得忠心，迟早还会为这个奴役他们的组织的强大而感到自豪。
+He deliberately arranged these people to be a little closer to the machinery. Even for modern people, watching construction machinery at work at such a close distance would be very shocking, let alone a few natives who had never been out of the county. When they discovered that the transmigrators possessed not only them, the common people, but also a huge power that no one could resist, they would become loyal, and sooner or later they would be proud of the strength of the organization that enslaved them.
 
-　　当看到挖掘机发出巨大的吼叫声，把挖掘臂向他们这边转过来的时候，几个人吓得扭头就跑，直到被邬德拦住
+When they saw the excavator let out a huge roar and turn its digging arm towards them, the few of them were so scared that they turned and ran, until they were stopped by Wu De.
 
-　　“跑什么，干活！”
+"What are you running for? Get to work!"
 
-　　俘虏们跪在地上苦苦哀求，虽然叽里呱啦的听不明白，但是邬德还是明白他们是害怕那巨大的机械——以为是某种怪兽。直到邬德指示他们看到透明的盒子里也坐着个海贼才知道这是由人操作的。
+The captives knelt on the ground and begged bitterly. Although he couldn't understand their gibberish, Wu De still understood that they were afraid of the huge machine—they thought it was some kind of monster. It wasn't until Wu De pointed out to them that there was also a pirate sitting in the transparent box that they knew it was operated by a person.
 
-　　工地上的挖掘机、推土拖拉机、来回奔走的小翻斗车——机械化的施工带来的震撼是无与伦比的，相比之下，自己一铲土一铲土的挖，一簸箕一簸箕的挑运，简直和蚂蚁也差不了多少。
+The excavators, bulldozers, and small dump trucks running back and forth on the construction site—the shock brought by mechanized construction was unparalleled. In comparison, digging with a shovel and carrying with a basket was no different from an ant.
 
-　　有邬德这个煞星还有袁秋实这么个下手毒辣的小打手在旁，谁也不敢懈怠，俘虏们干得十分卖力。半天相处下来他们发觉这个邬头目虽然一脸煞气，但是与以狠揍他们为乐趣的少年相比还是好的多。
+With a devil like Wu De and a ruthless little thug like Yuan Qiushi by their side, no one dared to slack off. The captives worked very hard. After half a day of getting along, they found that although this Leader Wu had a fierce look on his face, he was much better than the teenager who took pleasure in beating them.
 
-　　干到晚上收工，邬德把他们都带到了单独的一个窝棚，这里是嘹望塔的监视范围之内，营地周围又是铁丝网围起来的，根本不用担心他们逃跑。河马提了个医药箱在那里等候了，根据中午的检查情况，他要对这些劳工进行必要的治疗。在强迫他们再次洗澡和煮衣服之后，几个人赤条条的被带到河马面前，河马拿这一个勺子，把稍稍有些烫的热水淋到他们身上，接着用一把不知道哪里来的草刷子狠命的刷着。几个人别说惨叫连啃都不敢啃一声。
+When they finished work in the evening, Wu De took them all to a separate shed. This place was within the surveillance range of the watchtower, and the camp was surrounded by barbed wire, so there was no need to worry about them escaping. He Ma was waiting there with a medicine box. According to the examination at noon, he was going to give these laborers the necessary treatment. After forcing them to take another bath and boil their clothes, the few of them were brought naked before He Ma. He Ma took a ladle and poured slightly hot water on them, and then scrubbed them hard with a grass brush from who knows where. The few of them didn't even dare to make a sound, let alone scream.
 
-　　“你这是在干啥？”
+"What are you doing?"
 
-　　“治疥虫感染。这是把感染的部分刷开，好用药。”河马解释着，用纱布将一种软膏用力的擦在皮肤上。
+"Treating scabies infection. This is to brush open the infected parts so that the medicine can be applied." He Ma explained, rubbing a kind of ointment on their skin with gauze.
 
-　　“硫磺软膏，这东西要不是[文总][y002]提醒我都忘记了，”河马一面用力的擦，一面说，“21世纪很少有人被疥虫感染了。”
+"Sulfur ointment. I would have forgotten about this if [Wen Zong][y002] hadn't reminded me," He Ma said while rubbing hard. "Few people in the 21st century are infected with scabies."
 
-　　“还有，”河马又开始给他们涂抹其他药膏，“这几天不要让他们洗澡，等这个疗程结束了再洗。”
+"Also," He Ma began to apply other ointments to them, "don't let them take a bath for the next few days. Wait until this course of treatment is over."
 
-　　“难治么？”
+"Is it difficult to treat?"
 
-　　“很容易的，不过这玩意皮肤接触就会传染，很讨厌。”河马自己全身装备防护。
+"It's very easy, but this thing is contagious through skin contact, which is very annoying." He Ma was fully equipped with protective gear himself.
 
-　　“我要不要也涂一点？”邬德有点担心，这玩意发作起来似乎很痒的样子，今天他不止一次地看到这些人拼命抓挠的样子。
+"Should I apply some too?" Wu De was a little worried. This thing seemed to be very itchy when it flared up. He had seen these people scratching desperately more than once today.
 
-　　“没关系，洗澡换衣服就可以了。尽量不要和他们有皮肤接触。对了，他们睡觉的铺草，每天都要拿出来烧掉。”
+"It's okay, just take a bath and change your clothes. Try not to have skin contact with them. By the way, the straw they sleep on must be taken out and burned every day."
 
-　　干完这一切，河马又拿出一堆小药片叫他们吃下去，虽然看到这些白色的小圆片心存疑虑，但是在邬德的高压态势下还是都吞了下去。
+After all this was done, He Ma took out a pile of small pills and told them to eat them. Although they were suspicious of these small white round pills, they still swallowed them under Wu De's high pressure.
 
-　　“可惜我不懂中医，也不认得中草药。”河马摇了摇头，“我记得驱虫也是药方的。”
+"It's a pity I don't know traditional Chinese medicine, nor do I recognize Chinese herbal medicine." He Ma shook his head. "I remember that deworming is also a prescription."
 
-　　“符有地。”
+"Fu Youdi."
 
-　　“在！”经过一下午的磨合之后，每个人都会很快的对点名作出反应了，而且也稍微懂一点海贼头目说的话的意思了——代价是屁股上伤痕累累。
+"Here!" After an afternoon of breaking in, everyone could quickly respond to the roll call, and they also understood a little of what the pirate leader was saying—the price was a bruised and battered butt.
 
-　　“你当队长，”邬德任命他作头头的道理很简单——他不配，这个本地土生土长的农民力气不大，又不够机伶，说话都不大利索，当队长肯定不服众，他要得就是要不服众的效果。
+"You are the team leader." The reason Wu De appointed him as the leader was very simple—he was not worthy. This local-born farmer was not strong, not smart enough, and could not speak fluently. He would definitely not be able to command the respect of the others as a team leader. What he wanted was the effect of not being able to command respect.
 
-　　“我？”符有地还有点闹不明白。
+"Me?" Fu Youdi was still a little confused.
 
-　　“对，以后你们领饭，带工都由你负责，出了差池唯你是问！”
+"Yes, from now on, you will be in charge of getting your meals and leading the work. If anything goes wrong, you will be the only one to be held responsible!"
 
-　　[吴南海][y009]原来是按穿越众的份额，每人正餐四两大米的标准给的饭，这对于从事重体力劳动的人来说也差不多。但是邬德并不打算让他们吃饱，在他看来吃饱应该是一种奖励，不能轻易的给予。就叫[吴南海][y009]去掉一半。
+[Wu Nanhai][y009] had originally given them rice according to the share of the transmigrators, with four liang of rice per person for a regular meal, which was about right for people engaged in heavy physical labor. But Wu De did not intend to let them eat their fill. In his opinion, eating one's fill should be a reward and should not be given easily. So he asked [Wu Nanhai][y009] to cut it by half.
 
-　　“那够吃么……”[吴南海][y009]怀疑的说。
+"Is that enough to eat..." [Wu Nanhai][y009] said doubtfully.
 
-　　“就是得不够吃才好。人吃饱了容易多想事。”
+"It's better if it's not enough. People tend to think too much when they are full."
 
-　　“没有吧，我吃饱了就想打瞌睡……”
+"I don't think so. I just want to take a nap when I'm full..."
 
-　　“那是你。给我搀水，对，多搀点，给我搞成海鲜粥。”
+"That's you. Add water for me, yes, add more, make it into seafood congee for me."
 
-　　等袁秋实用个木桶把粥领来，米饭已经成了满满一桶稀粥，但即使这样桶盖一揭开，几个俘虏还是目瞪口呆：雪白的大米粥，还有很多很多的鱼肉和贝肉在漂动，香气扑鼻——临高虽然沿海，但是一般小民哪有什么机会吃到新鲜的鱼类，最多就是农忙三抢的时候主家给蒸一段臭咸鱼。要不是已经给邬德整怕了，早扑上来了。
+When Yuan Qiushi brought the congee in a wooden bucket, the rice had become a full bucket of thin congee. But even so, when the lid of the bucket was opened, the few captives were still dumbfounded: snow-white rice congee, with a lot of fish meat and shellfish meat floating in it, and the aroma was overwhelming—although Lingao was coastal, ordinary people rarely had the opportunity to eat fresh fish. At most, they would be given a piece of smelly salted fish by their masters during the busy farming season. If they hadn't been scared by Wu De, they would have rushed up long ago.
 
-　　给俘虏发了不知道谁做的木碗和筷子，分饭的事情就归他刚任命的队长去负责了。
+The captives were given wooden bowls and chopsticks made by who knows who, and the task of distributing the food was left to the newly appointed team leader.
 
-　　“谁敢在吃饭的时候闹事，不但这顿没得吃，明天一天都不给饭吃！”邬德恶狠狠的撂下这话，自顾自地走了。他知道，再胆怯的人，一旦有了领导的支持，也会变得肆意妄为起来，更不用说吃饭这样事关切身利益的事情了。
-[y002]: /characters/y002 "文德嗣"
-[y009]: /characters/y009 "吴南海"
+"Whoever dares to make trouble during meals will not only have nothing to eat for this meal, but will also not be given any food for the whole of tomorrow!" Wu De said fiercely and walked away. He knew that even the most timid person, once they had the support of the leader, would become wanton and reckless, not to mention matters of personal interest such as eating.
+[y002]: /characters/y002 "Wen Desi"
+[y009]: /characters/y009 "Wu Nanhai"
