--- a/_posts/2009-11-19-2-03300.md
+++ b/_posts/2009-11-19-2-03300.md
@@ -1,80 +1,80 @@
 ---
 layout: post
-title: 第三十三节 临高的反攻（三）
+title: Section 33: Lingao's Counterattack (Part 3)
 category: 2
 path: 2009-11-19-2-03300.md
 tag: [normal]
 ---
 
-　　“我没子弹啦！”
+"I'm out of bullets!"
 
-　　“子弹，子弹在哪里！”
+"Bullets, where are the bullets!"
 
-　　临战前每个人都发了90发子弹，SKS－D步枪又是用AK的30发弹夹的，大家自信这样的装备就算是满洲铁骑来冲阵都能打个稀巴烂——话是没错，但显然不是在他们这些人手里。看到敌人并没有象游戏电影里那样随着枪响就倒地完蛋，接着溃不成军，而是咬着牙，狂呼着猛扑上来，许多人立刻就慌了神，有的人忘记去拿弹夹，还有人在身上乱摸弹夹，好好的弹夹死活拽不出来。
+Before the battle, everyone was issued 90 rounds of ammunition. The SKS-D rifle used the AK's 30-round magazine. Everyone was confident that with such equipment, even the Manchu iron cavalry would be smashed to pieces—that was true, but obviously not in their hands. Seeing that the enemy did not fall to the ground and die with the sound of gunfire as in games and movies, and then collapse into a rout, but gritted their teeth and charged forward with wild cries, many people immediately panicked. Some people forgot to grab their magazines, and others fumbled for their magazines on their bodies, but couldn't pull them out.
 
-　　“大家不要乱，稳住！”何鸣沿着土垒跑着喊着，他深知这些人的军事训练还比不上新兵，也没有真刀真枪的打过仗，临时乱了阵脚是难免的，所以拼命的来回奔走，维持住军心。
+"Everyone, don't panic, hold on!" He Ming ran along the earthen rampart, shouting. He knew very well that these people's military training was not even as good as that of new recruits, and they had never fought a real battle. It was inevitable that they would lose their composure temporarily, so he ran back and forth desperately to maintain morale.
 
-　　乘着这个火力停歇的空隙，乡勇们已经把许多堆满沙袋土包的手推车推到土垒下，弓弩手们靠着手推车的掩护，乱箭齐发，有人中了箭，倒在地上嚎叫着，河马带着医疗组刚想过去救护，就给人猛得一堆，接着脑袋上一疼，却发现一个家伙把步枪丢在他脑袋上，失魂落魄的往后面跑去。
+Taking advantage of this lull in the firepower, the local braves had already pushed many wheelbarrows full of sandbags and earth bags to the bottom of the earthen rampart. The archers and crossbowmen, under the cover of the wheelbarrows, fired a volley of arrows. Someone was hit by an arrow and fell to the ground, howling. He Ma, with the medical team, was just about to go over to rescue him when he was suddenly pushed hard. Then he felt a pain in his head and found that a guy had thrown his rifle at his head and was running away in a panic.
 
-　　“快回来！你个懦夫！”河马吼叫着，脑袋上幸亏有钢盔，不然这八斤半砸到脑袋上不让他开瓢了？
+"Come back! You coward!" He Ma roared. Fortunately, he had a steel helmet on his head. Otherwise, if this eight-and-a-half-jin thing hit his head, wouldn't it crack his skull?
 
-　　正吼着，忽然铁丝网外面猛得喷出一股白烟，炮声轰鸣，河马下意识的低下头去，只听到脑袋上的钢盔一阵叮当乱响，身上也被砸到些东西，生疼生疼的，抬头一看，从土垒上已经栽倒了一个人在面前，满脸都是血，十分骇人，一拖之下发觉他还在呻吟，知道还有救。
+As he was roaring, a puff of white smoke suddenly spewed out from outside the barbed wire fence, and the sound of cannons roared. He Ma subconsciously lowered his head and only heard a clanging sound on his steel helmet. He was also hit by something on his body, which was very painful. He looked up and saw that a person had already fallen in front of him from the earthen rampart, his face covered in blood, which was very frightening. When he dragged him, he found that he was still groaning, and knew that he could still be saved.
 
-　　两门拉到土垒前的虎蹲炮的齐射压倒了已经乱了手脚的守卫者，这种炮虽然射程威力都很有限，但是在这不到五十步的地方同时开火，就是石子碎铁也有了足够的杀伤力，不少人当即受伤倒地。第一次面对真刀真枪的战场的穿越者们谁也没表现出王八之气，镇定自若的冲上去手起刀落潇洒的砍人，二门发射石子碎铁的小铁炮的轰鸣就成了压垮他们脆弱心灵的最后一根稻草。看到身边的人满脸是血的在地上惨叫，有人终于支撑不住了，尖叫着连滚带爬的逃走了。气得何鸣真想掏出手枪当场枪毙几个。这会要是有一个排的PLA——他想，就算是用三八大盖一分钟内也能把这群衣不蔽体的乡勇打垮——他们太低估了对手的战斗意志，太高估了现代人的心理承受能力。
+The volley from the two Tiger Squatting Cannons pulled to the front of the earthen rampart overwhelmed the already flustered defenders. Although the range and power of this kind of cannon were very limited, when they fired at the same time at a distance of less than fifty paces, even stones and scrap iron had enough lethality. Many people were injured and fell to the ground immediately. The transmigrators, who were facing a real battlefield for the first time, did not show any signs of being a badass, calmly rushing up and cutting people down with their swords. The roar of the two small iron cannons firing stones and scrap iron became the last straw that crushed their fragile minds. Seeing the people around them screaming in pain on the ground with their faces covered in blood, someone finally couldn't hold on anymore and ran away screaming and crawling. He Ming was so angry that he wanted to take out his pistol and shoot a few of them on the spot. If there was a platoon of PLA at this time—he thought, even with a Type 38 rifle, they could defeat this group of poorly clothed local braves in a minute—they had underestimated the enemy's will to fight and overestimated the psychological endurance of modern people.
 
-　　“开枪开枪！”何鸣帮一个和自己的弹夹闹意见的人拽出了弹夹，帮他安上，“不断的给我放！”
+"Fire, fire!" He Ming helped a person who was having trouble with his magazine pull out the magazine and put it on for him. "Keep firing for me!"
 
-　　有些最果敢的乡勇们已经爬上了土垒，何鸣把军事组的七八个人集中起来，连续的集火射击，SKS－D的30发弹夹给了他们很大的优势，滚烫的步枪弹壳落了一地，聚集在突破口外的乡勇们顿时倒下一片，余下的都溃逃下去。
+Some of the most courageous local braves had already climbed onto the earthen rampart. He Ming gathered the seven or eight people from the military group and fired continuously in concentrated fire. The 30-round magazine of the SKS-D gave them a great advantage. The hot rifle casings fell to the ground, and the local braves gathered outside the breach immediately fell in a heap, and the rest fled in disarray.
 
-　　这次小反击稳定住了战线，从各面射来的子弹开始密集起来在。趁着这个当口他和其他军事组员的来回鼓动，把原本有点慌了神的守卫者们的情绪安抚下来，李军在后面连踢带踹的把那些逃走的家伙又赶了上来。医疗组赶紧把地上受伤的人都拖到屋子里去，免得鲜血直流的场面影响士气。
+This small counterattack stabilized the battle line, and the bullets from all sides began to become dense. Taking advantage of this opportunity, he and other members of the military group went back and forth to encourage them, and calmed down the emotions of the defenders who were originally a little flustered. Li Jun kicked and punched the guys who had run away and drove them back up. The medical team quickly dragged the injured people on the ground into the house to prevent the scene of blood from affecting morale.
 
-　　“大家不要慌，注意脑袋别露得太多，射击不要停，敌人上不来……”何鸣沿着土垒走着，喊着。
+"Everyone, don't panic. Be careful not to expose your heads too much. Don't stop shooting. The enemy can't get up..." He Ming walked along the earthen rampart, shouting.
 
-　　黄守统还想在坚持攻一次，他带来的乡勇们已经涌到了土垒下面，但是现在他们全都陷入了几个营地之间的交叉火力，不断有人倒下，乡勇们死伤惨重，射击来自四面八方，显然海贼的火器比大明的任何一种都要射得远，而且他们不时还会遭到来自高处的射击，威力极大，很多人都是在枪声一响之后头盖骨就不见了。
+Huang Shoutong wanted to insist on attacking one more time. The local braves he brought had already rushed to the bottom of the earthen rampart, but now they were all caught in the crossfire between several camps. People were constantly falling, and the local braves suffered heavy casualties. The shooting came from all directions. Obviously, the pirates' firearms had a longer range than any of the Ming Dynasty's. Moreover, they were often shot at from high places, and the power was extremely great. Many people's skulls were gone after a gunshot.
 
-　　炮手们遭到了集中射击，顷刻之间全部毙命，打算支援登垒的弓弩手再也没有射箭的机会就被打死了，聪明地躲在堆沙包土筐的车子下面。密集的子弹象瓢泼大雨一样的洒在乡勇们身上，乡勇们只在土垒下坚持了片刻，就在弹雨下溃散了。他们始终没能准确的估计SKS步枪的射程，因此许多人在返身逃跑的路上被击倒在地。
+The gunners were subjected to concentrated fire and were all killed in an instant. The archers and crossbowmen who were planning to support the assault on the rampart were killed before they had a chance to shoot their arrows. They cleverly hid under the carts piled with sandbags and earth baskets. The dense bullets rained down on the local braves like a torrential downpour. The local braves only held on for a moment under the earthen rampart before they were scattered by the rain of bullets. They had never been able to accurately estimate the range of the SKS rifle, so many people were shot down on their way back.
 
-　　何鸣看到乡勇们开始溃逃，赶紧用对讲机下令停火，即使这样，凌乱的枪声也隔了好一会才停歇下来。
+When He Ming saw that the local braves were beginning to flee, he quickly ordered a ceasefire with the walkie-talkie. Even so, the scattered gunshots did not stop for a while.
 
-　　“为什么停火？”一个人提着SKS跑了过来，“正打得带劲！”
+"Why the ceasefire?" A person ran over with an SKS. "It was just getting exciting!"
 
-　　何鸣一看这家伙正是刚才丢了步枪逃走，又给后面的李军揪回来的人，看着他此时兴奋得鼻翼起伏，满脸放光的样子，再联想到刚才他失魂落魄的模样，不禁摇了摇头。
+He Ming saw that this guy was the one who had just thrown away his rifle and run away, and was then caught by Li Jun from behind. Seeing his excited look with his nostrils flaring and his face glowing, and then thinking of his dejected look just now, he couldn't help but shake his head.
 
-　　“我们要得是俘虏，不要死人。”他转身呼叫机动队，叫他们出去拦截溃逃的乡勇。
+"We want prisoners, not dead people." He turned around and called the mobile team, telling them to go out and intercept the fleeing local braves.
 
-　　农用车的出现让剩余的乡勇大惊失色，原先他们为了预备着可能要和“妖车”作战，都带了装满火药和油的瓶子，上面还洒了许多鸡血，但是此时谁还想得到这些，只是撒开腿跑路了，可惜人在河滩平地上如何能与四驱农用车比快？很快，在农用车迂回包围并且并联着射倒几个乡勇之后，大部分人都在河滩上挤做了一团，熊卜佑连着喊“降者免死”，多数人都跪地投降。只有几个跑的快或者水性好的才逃脱了。
+The appearance of the agricultural vehicles made the remaining local braves turn pale with fright. Originally, in preparation for a possible battle with the "demon vehicles," they had all brought bottles filled with gunpowder and oil, and had even sprinkled a lot of chicken blood on them. But at this time, who could still think of these things? They just ran for their lives. Unfortunately, how could a person on the flat river beach be faster than a four-wheel-drive agricultural vehicle? Soon, after the agricultural vehicles outflanked and surrounded them and shot down a few local braves in parallel, most of them were crowded together on the river beach. Xiong Buyou repeatedly shouted "Those who surrender will be spared," and most of them knelt down and surrendered. Only a few who ran fast or were good swimmers escaped.
 
-　　溃逃是如此的迅速，连撤退的黑烟也来不及放出去，何鸣留下一部分人清理战场，出动了八辆农用车，带着五十多人去抄博铺敌人的后路了。
+The rout was so rapid that they didn't even have time to release the black smoke for retreat. He Ming left some people to clean up the battlefield and dispatched eight agricultural vehicles with more than fifty people to cut off the enemy's retreat at Bopu.
 
-　　对博铺攻击是从中午开始的，因为早就得到警报告，原来在周边的伐木队和开采海石花、蛎房的劳动组早已退进了营地里。符柏文一面叫民壮们挥舞旗子，一面把带来的三眼铳放个不停，加上拼命的敲锣打鼓，搞得声势极为浩大，正当在他自认为足够安全的一处山坡上指挥一切的时候，身边的亲随忽然胸口开了个洞倒了下去，把他吓得掉头就走。民壮们见老爷忽然跑了，也都丢下手中的各式家伙四散奔逃了，因此他们跑得比黄守统的乡勇还要早，当然，也没发那个撤退的讯号。
+The attack on Bopu began at noon. Because they had received a warning long ago, the logging teams and the labor groups that were originally collecting sea stone flowers and oysters in the surrounding area had already retreated into the camp. Fu Baiwen, on the one hand, ordered the militia to wave their flags, and on the other hand, he kept firing the three-eyed blunderbusses he had brought. In addition, he desperately beat gongs and drums, creating a huge momentum. Just as he was directing everything from a hillside that he thought was safe enough, the attendant beside him suddenly had a hole in his chest and fell down, which scared him so much that he turned and ran. When the militia saw that the master had suddenly run away, they also dropped the various weapons in their hands and fled in all directions. Therefore, they ran earlier than Huang Shoutong's local braves, and of course, they did not send out the retreat signal.
 
-　　不过发与不发，此时没有什么区别了，刘大霖和黄守统策划的左右两路人马，现在已经全部溃散。如果说谁更高明一些，那么符柏文的及时逃跑至少救了右路军的大多数民壮，使得他们免于被俘——何鸣的抓捕机动队只抓到了一些老弱。
+However, whether it was sent or not, it made no difference at this time. The left and right routes planned by Liu Dalin and Huang Shoutong had now all been routed. If one were to say who was more brilliant, then Fu Baiwen's timely escape at least saved most of the militia of the right route army, saving them from being captured—He Ming's capture mobile team only caught some of the old and weak.
 
-　　战后的百仞滩弥漫着一股血腥味，从行政区的土垒下到壕沟边，倒了许多的尸体，经历了一场“激战”的宅男们拖着步枪，都有点呆若木鸡的感觉。自己杀人了？似乎是有些不相信，但是这满地的死尸明明白白的告诉了他们的作为。有人在呕吐，有人在掩面而泣，也有人莫名其妙的狂笑……
+After the battle, Bairen Tan was filled with the smell of blood. From under the earthen rampart of the administrative area to the edge of the trench, there were many corpses. The otaku who had experienced a "fierce battle" dragged their rifles, all looking a little dazed. Did I kill someone? It seemed a little unbelievable, but the dead bodies all over the ground clearly told them what they had done. Some were vomiting, some were covering their faces and crying, and some were laughing wildly for no reason...
 
-　　看来穿越者的心理干预问题也得提上议事日程。[萧子山][y001]想着，一路往行政区走去，他今天在车辆物资场观看了战斗——这几天，穿越者们开始实行一种应急制，在任何一个营地里都有几名执委，而不是大家都集中在一起，这是为了避免被人一锅端。
+It seems that the issue of psychological intervention for the transmigrators also needs to be put on the agenda, [Xiao Zishan][y001] thought as he walked towards the administrative area. He had watched the battle from the vehicle and material yard today—in the past few days, the transmigrators had begun to implement an emergency system. There were several executive committee members in any one camp, instead of everyone being concentrated together. This was to avoid being wiped out in one fell swoop.
 
-　　战场上，军事组的人拿着上了刺刀的SKS步枪，警惕的翻看着每一具尸体，如果还能动弹或者有生命的迹象，就由医务组抬到一边，除非是轻伤员，否则他们不会得到马上救治，只有能挨得过足够时间的人，医务组才会治疗他们。再说这场战斗穿越众们受伤的也很多。
+On the battlefield, the members of the military group, holding SKS rifles with bayonets fixed, cautiously turned over every corpse. If there were still signs of movement or life, the medical team would move them to the side. Unless they were lightly wounded, they would not receive immediate treatment. Only those who could endure for a sufficient amount of time would be treated by the medical team. Besides, many of the transmigrators were also injured in this battle.
 
-　　“有伤亡么？”看到时袅仁也在，[萧子山][y001]问道。
+"Are there any casualties?" Seeing that Shi Niaoren was also there, [Xiao Zishan][y001] asked.
 
-　　“目前没有死亡，但是受伤不少。”时袅仁说，“多数是虎蹲炮打伤的，很多人伤在脸部和四肢。”
+"There are no deaths at present, but many are injured," Shi Niaoren said. "Most of them were injured by the Tiger Squatting Cannon. Many people were injured in the face and limbs."
 
-　　“哦？”
+"Oh?"
 
-　　“大家身上有防刺服，脑袋上有钢盔，这种小铁炮有什么用？”时袅仁轻蔑的用下巴指了一下倒在土垒下的炮车，两门短小难看的小铁炮翻倒在地上，粗糙的铁质、难看的造型让人很难把它和火炮两个字联系在一起。
+"Everyone has anti-stab vests and steel helmets on their heads. What's the use of this kind of small iron cannon?" Shi Niaoren pointed his chin contemptuously at the cannon carriage that had fallen under the earthen rampart. The two short and ugly small iron cannons were overturned on the ground. The rough iron quality and ugly shape made it difficult to associate them with the word "cannon."
 
-　　“初步看下来还算走运，没有伤到眼睛的。伤势最重的一个是中箭的，胳膊上，”时袅仁比划着，“他的胳膊以后不大好用力了。”
+"From a preliminary look, we are quite lucky. No one's eyes were injured. The most seriously injured one was hit by an arrow in the arm," Shi Niaoren gestured. "His arm will not be very useful in the future."
 
-　　[萧子山][y001]默然：这总比残废好。不过这话他不便说。
+[Xiao Zishan][y001] was silent: this was better than being disabled. But he couldn't say that.
 
-　　伤亡报告很快就出来了：
+The casualty report came out soon:
 
-　　穿越者一共二十一人受伤，包括一个冒失的去捏SKS步枪枪管的烫伤在内。
+A total of twenty-one transmigrators were injured, including one who was burned by recklessly grabbing the barrel of an SKS rifle.
 
-　　相比之下进攻的乡勇仅仅在两地的战场遗弃尸体就有一百多具，丢弃的伤员三十多人，这些伤员伤势严重，大多会在一二天内死去。被俘的有一百三十多人，此刻都被拘押在河滩上，神情萎靡。
+In contrast, the attacking local braves left more than a hundred corpses on the battlefields of the two places alone, and more than thirty wounded were abandoned. These wounded were seriously injured and most of them would die in one or two days. More than one hundred and thirty people were captured and were now detained on the river beach, looking dejected.
 
-　　缴获的东西不少，除了许多刀枪弓弩，还有二门虎蹲炮，锣鼓旗子，粗糙的手推车，甚至还有好几车火药和充当炮弹的碎铁。这些东西，都由计委的人员清点入库，武器可以以后用来武装土著部队，再不济也能回炉，火炮和碎铁没什么用，就给未来的钢铁组当原料吧。手推车很有用，工地上能用得到。至于那些火药，虽然化学组的人看了之后都对其表示藐视，还是储存了下来。
+A lot of things were captured, including many swords, spears, bows, and crossbows, as well as two Tiger Squatting Cannons, gongs, drums, flags, rough wheelbarrows, and even several carts of gunpowder and scrap iron used as cannonballs. These things were all counted and put into storage by the personnel of the Planning Committee. The weapons could be used to arm the native troops in the future, or at worst, they could be melted down. The cannons and scrap iron were useless, so they would be used as raw materials for the future steel group. The wheelbarrows were very useful and could be used on the construction site. As for the gunpowder, although the people in the chemistry group all expressed their contempt for it after seeing it, it was still stored.
 
-　　穿越者们的最大收获是俘获了三匹马，海南本身不出马，都是从西南引进的，这些马个头不大，当骑兵用马可能不行，但是充当畜力没问题。另有五六匹死马，统一都交给农业组处置。
-[y001]: /characters/y001 "萧子山"
+The biggest gain for the transmigrators was the capture of three horses. Hainan itself did not produce horses, they were all introduced from the southwest. These horses were not large and might not be suitable for cavalry, but they were fine as draft animals. There were also five or six dead horses, which were all handed over to the agriculture group for disposal.
+[y001]: /characters/y001 "Xiao Zishan"
