--- a/_posts/2009-11-2-2-01600.md
+++ b/_posts/2009-11-2-2-01600.md
@@ -1,75 +1,75 @@
 ---
 layout: post
-title: 第十六节 奋战
+title: "Section 16: The Desperate Fight"
 category: 2
 path: 2009-11-2-2-01600.md
 tag: [normal]
 ---
 
-　　郭逸一个虎扑趴倒满是乱石的地上，胸口被石头咯了一下，差点背过气去。人在危急关头爆发出来的潜力还是惊人的，连续几个翻身就爬到了块大石头旁，这一分钟不到的时间里，他已经瞥见萨琳娜似乎是中了箭，倒在地上不动了。
+Guo Yi dove onto the rocky ground. A stone jabbed him in the chest, nearly knocking the wind out of him. The potential that a person can unleash in a moment of crisis is astonishing. In a series of rolls, he scrambled to the side of a large rock. In less than a minute, he had already glimpsed Sarlina, apparently hit by an arrow, lying motionless on the ground.
 
-　　薛子良的反应比他还快，大约因为他人高马大，目标明显，多数箭都是朝他去的，瞬间就中了四五枝，郭逸只见他趴在地上如同鱼一般在满是卵石的地上快速游动，一手甩下背上的背包，一手已经拽住了萨琳娜的背包带，将她拖了过来。羽箭还是不住的朝这边招呼，准头却差了许多。
+Xue Ziliang reacted even faster. Perhaps because he was tall and a clear target, most of the arrows were aimed at him. He was hit by four or five in an instant. Guo Yi saw him on the ground, slithering like a fish across the pebbly surface, shrugging off his backpack with one hand while grabbing the strap of Sarlina's pack with the other, dragging her over. Arrows continued to fly in their direction, but their accuracy had worsened considerably.
 
-　　“郭，开枪！”薛子良一边拉人，一边回头嚎叫着。郭逸被他满脸扭曲的肌肉吓得一激凛，他到底是个常年坐办公室的人士，应变能力差点，这会刚刚回过神来，端起手枪朝着弓箭射来的方向连开了几枪，混乱之中也不知道打了几发，草丛里瞬间传来了痛苦的尖叫声。
+"Guo, shoot!" Xue Ziliang roared as he pulled the woman. Guo Yi was startled by the twisted muscles on his face. He was, after all, a man who had spent years sitting in an office, and his reaction time was a bit slow. He had just come to his senses. He raised his pistol and fired several shots in the direction the arrows came from. In the chaos, he didn't know how many rounds he had fired, but a pained scream immediately came from the grass.
 
-　　趁着这个空挡，薛子良已经把萨琳娜拽到了自己的背上，猫着腰猛跑起来，郭逸赶紧跟了上来，仓皇中他感到自己的身体被人从后面推了一把，大约是中箭了，可是他根本不敢去看。
+Taking advantage of this opening, Xue Ziliang had already hoisted Sarlina onto his back and was running in a crouch. Guo Yi quickly followed. In his haste, he felt a push from behind, as if he had been hit by an arrow, but he didn't dare to look.
 
-　　从附近的树林和荒草中窜出十多个人，凶猛扑来，手执六七尺长的白木棍子，朝着他们乱打。郭逸猝不及防，身上挨了好多棍子，幸亏背包替他挡掉了不少力量。他连开了二枪击倒了一个才把其他人逼退了。
+More than a dozen people burst out from the nearby woods and tall grass, charging fiercely, wielding six-to-seven-foot-long white wooden staves, and beating at them wildly. Caught off guard, Guo Yi was hit many times, but fortunately, his backpack absorbed much of the force. He fired two shots, knocking one down and forcing the others back.
 
-　　“往前冲！”薛子良吼着，顺手拣起掉在地上的一根白木棍子——棍子的主人衣着古怪，正痛苦在地上扭动呻吟。他虽背着一个人，但自恃力大被并不惊惶，刚才中的几箭不是被防弹衣挡掉了就是没中要害。此时他知道翻身回跑断然没有生路，唯有往前冲才有可能破围。
+"Charge forward!" Xue Ziliang roared, picking up a white wooden staff that had fallen to the ground—its owner, dressed in strange clothes, was writhing and groaning in pain on the ground. Although he was carrying a person on his back, he was confident in his strength and was not alarmed. The arrows that had hit him earlier had either been stopped by his bulletproof vest or had not hit vital areas. At this moment, he knew that turning back to run was a dead end; only by charging forward could they possibly break through the encirclement.
 
-　　郭逸刚才脑袋上挨了一棍，此时头晕目眩，而且糟糕的是，混乱中打光了子弹的手枪也掉了。但是当他看见一个穿青衫的人，提着一柄长刀，在在前面指挥人群阻拦追杀，他的精神忽然振作，大吼一声，直向他奔去。那人看他过来，并不躲避，挥舞着刀迎了过来。这一瞬间郭逸的脑袋轰了一声——这是在演古装剧吗？！来人明明头挽发髻，身穿青衫长衫，犹豫间对方的刀已经劈砍过来，正中他的肩胛，剧痛让他几乎木棍脱手，周边的几个人也冲过来用白木棍子朝他乱打，郭逸倒在地上，一面拼死护住脑袋，一面挥舞着木棒抵抗，惊惶中心思却清明如镜——自己要被这些人活活打死了！正在绝望中，忽听霹雳一般的巨吼：
+Guo Yi had just taken a blow to the head and was now dizzy. To make matters worse, he had dropped his pistol, which was out of ammunition, in the chaos. But when he saw a man in a blue robe directing the crowd to block and kill them with a long saber, his spirits suddenly lifted. With a great roar, he rushed straight at him. The man, seeing him coming, did not dodge but swung his saber to meet him. In that instant, Guo Yi's mind went blank—was this a historical drama?! The man clearly had his hair in a bun and was wearing a long blue robe. In his moment of hesitation, the opponent's saber had already slashed down, hitting him squarely on the shoulder blade. The intense pain almost made him drop his staff. Several others rushed over and beat him with their white wooden staves. Guo Yi fell to the ground. As he desperately protected his head and swung his staff to resist, his mind, in its panic, became as clear as a mirror—he was going to be beaten to death by these people! In his despair, he suddenly heard a thunderous roar:
 
-　　“son of bitch！”
+"Son of a bitch!"
 
-　　小郭面前的一个家伙的脑袋忽然在他眼前开了瓢，脑浆、鲜血和碎骨片一起迸飞出去，直喷了他一身，那红白相间四散纷飞的景色让他几十年之后还记忆犹新。
+The head of a man in front of Little Guo suddenly exploded before his eyes. Brains, blood, and bone fragments flew out, spraying all over him. The sight of the red and white mixture scattering everywhere remained fresh in his memory for decades.
 
-　　已经跑出一段路的薛子良看到同伴被困，赶紧放下萨琳娜又重新赶回来，背后偷袭一棍子砸烂了一个人的脑袋，旁边的人看到来人如此凶悍，一时间都慌乱起来，乘着着这会，郭逸连滚带爬的冲了过去。
+Xue Ziliang, who had already run some distance, saw his companion trapped. He quickly put Sarlina down and rushed back, sneaking up from behind and smashing a man's head with his staff. The people nearby, seeing how ferocious he was, panicked for a moment. Seizing the opportunity, Guo Yi scrambled and rolled away.
 
-　　然而这起子人却并不逃散，听到有人用不知道什么话吼了几声，十几个人又聚拢着冲了过来，薛子良因为要把萨琳娜背上，缓了片刻，被人追了上来，连中了几棍子，却都砸在萨琳娜身上，女地叫了一声，嘴里喷出血来，流了薛子良一脸。
+However, this group of people did not scatter. Hearing someone shout something in an unknown language, the dozen or so men regrouped and charged again. Because Xue Ziliang had to pick up Sarlina, he was delayed for a moment and was caught up. He was hit several times with staves, but the blows all landed on Sarlina. The woman cried out, and blood sprayed from her mouth, covering Xue Ziliang's face.
 
-　　郭逸见薛子良背着人行动累赘，眼看就要被人击倒，顾不得身上痛楚，赶紧挥舞着棍子返回来拦阻，冲在前面几个人用白木棍子蒙头乱打，像落下的雨点一般，此时此刻面临生死存亡，郭逸发了狂一般的挥舞棍子，硬生生的把对方逼退了好几步。
+Seeing that Xue Ziliang was encumbered by carrying a person and was about to be struck down, Guo Yi ignored the pain in his body and quickly returned with his staff to block the attackers. The men in front swung their white wooden staves wildly at his head, like falling rain. At this moment of life and death, Guo Yi went berserk, swinging his staff wildly and forcing the opponents back several steps.
 
-　　此时心定了一些，见对方都是些形容枯槁之辈，身高体量都比他们小一号，胆气又上来了。见他们挥舞棍子毫无章法，大开大阖的乱砸而已，便站定脚步，使出当年军训时跟教官学得刺刀术，乘他们慌乱后推间向前猛进一大步，一个前进突刺，木棍虽然没有枪头，但这全力一击也生生的将对方的下巴、鼻梁撞得粉碎，那人惨叫一声，扑倒在地，捂着脸满地乱滚，哀号连连。
+His heart settled a little. He saw that his opponents were all gaunt and emaciated, a size smaller than them in both height and build, and his courage returned. Seeing that they swung their staves without any technique, just wild, wide-open smashes, he stood his ground. Using the bayonet techniques he had learned from his instructor during military training, he took a large step forward as they fell back in disarray. With a forward thrust, although the wooden staff had no point, the full-force blow shattered the opponent's chin and nose. The man screamed, fell to the ground, and rolled around clutching his face, wailing incessantly.
 
-　　青衫人一面吼着什么，一面身先士卒的冲了过来，当面就是一刀。郭逸侧身一偏，一个“防左侧击”，棍子尾端狠命地砸在青衫人的脸上，电光火石的一瞬，随着一声惨叫一个黑白相间的眼珠飞了出来。
+The man in the blue robe, shouting something, led the charge himself, slashing with his saber. Guo Yi turned his body to the side, executed a "left-side defense," and viciously smashed the end of his staff into the blue-robed man's face. In a flash, with a scream, a black and white eyeball flew out.
 
-　　袭击他们的十几个人见他满身血污，面目狰狞。一棍就将头领打倒，心里顿时起了怯意，一声呼啸拖了青衫人落荒而走。许多年后，这一带的人们还活龙活现地传说着当时郭逸和薛子良以一当十，两杆哨棒打得对手落荒而逃的奋战情形。
+The dozen or so attackers, seeing him covered in blood, his face ferocious, and having taken down their leader with one blow, were suddenly filled with fear. With a cry, they dragged the blue-robed man and fled in disarray. Many years later, the people in this area still vividly told the story of how Guo Yi and Xue Ziliang fought off ten men each, their two staves sending the opponents fleeing in defeat.
 
-　　“好样的！郭，你简直就是Bruce Lee！”【注：李小龙的英文名】
+"Well done! Guo, you're practically Bruce Lee!"
 
-　　郭逸无力的挥了下手，软瘫在地上。大口地喘着气——他进安全部门多年，执行过的任务多了，从来没有这样胆战心惊的到奈何桥边走上一圈的感觉。此时精神一松懈，浑身疼，脸上湿乎乎的，一摸居然都是血，也不知道是自己的还是那伙莫名其妙的家伙的。
+Guo Yi waved his hand weakly and collapsed to the ground, panting heavily. He had been in the security department for many years and had been on many missions, but he had never been so terrified, feeling like he had taken a walk by the gates of hell. Now that the tension was gone, his whole body ached. His face was wet. He touched it and found it was all blood, he didn't know if it was his own or from those strange guys.
 
-　　“郭，我们快走吧，这伙人也许还会回来！”薛子良招呼着。
+"Guo, we have to go, quickly! These guys might come back!" Xue Ziliang called out.
 
-　　“我得看看情况！”郭逸说着，拿棍子当拐棍，一瘸一拐的走向倒下的几具尸体，他想搜查一下这伙奇怪的人物，顺便也看看能不能把手枪找回来。
+"I need to check the situation!" Guo Yi said. Using his staff as a crutch, he limped towards the fallen bodies. He wanted to search these strange characters and also see if he could find his pistol.
 
-　　重新上路又走了一公里，几个人实在都有些吃不住了，身上的伤痛愈来愈厉害，而且也未发觉有人追踪过来，决定先躲起来休息一下包扎伤口，再考虑何去何从。前面河流拐了一个大弯，形成一片乱石滩，河水在石头间倾泻奔腾，响声如雷。便在河畔寻找了一个僻静的地方，这里河岸边乱石堆的一个石窟，周边草高林密，旁人很难发现。
+After getting back on the road and walking for another kilometer, they were all exhausted. The pain from their injuries was getting worse. They hadn't noticed anyone following them, so they decided to hide and rest for a while to bandage their wounds before considering where to go next. Ahead, the river made a big bend, forming a rocky beach where the water rushed and roared over the stones like thunder. They found a secluded spot by the river, a small cave in a pile of rocks, surrounded by tall grass and dense woods, making it difficult for others to spot.
 
-　　薛子良用橡皮水袋从河边打来清水，洗去血污检视伤口。他虽然中箭如刺猬，实际上并没有着肉的，箭大部分射到了背包上，其他也都给防弹背心拦住了。除了脸、手在地上翻滚的时候磨破了一些之外，没有伤口，身上挨的棍子也最少。
+Xue Ziliang used a rubber water bladder to fetch clean water from the river to wash away the blood and inspect their wounds. Although he had been hit by arrows like a porcupine, none had actually pierced his flesh. Most of the arrows had hit his backpack, and the rest had been stopped by his bulletproof vest. Besides some scrapes on his face and hands from rolling on the ground, he had no wounds. He had also taken the fewest blows from the staves.
 
-　　郭逸也中了好几处箭，幸好他一出发就把防刺背心穿上了，没有射破只有一箭射在他的胳膊上，但被厚实的作训服布料缓冲了下，入肉很浅，稍微一拔就出来了。薛子良看着锈迹斑斑的箭头，连连摇头，用急救包里的消毒水给他消毒。
+Guo Yi had also been hit by several arrows. Fortunately, he had put on his anti-stab vest as soon as they set out. None had penetrated. Only one arrow had hit his arm, but it was cushioned by the thick fabric of his training uniform and had only gone in shallowly. It came out with a slight pull. Xue Ziliang looked at the rusty arrowhead and shook his head repeatedly, disinfecting the wound with antiseptic from the first-aid kit.
 
-　　“郭，你得注射破伤风。”他说着，“虽然伤口不深，但这箭头……”
+"Guo, you need a tetanus shot," he said. "Although the wound is not deep, this arrowhead..."
 
-　　“知道，现在不没办法么……”郭逸此时累脱了形，浑身都疼。不光是破伤风，他脑袋上被砸破了一个口子，按理说是该缝合一下伤口，眼下也只好先清洗消毒包扎起来，肩膀上的一刀被防刺背心挡住了，但是这会疼得连胳膊都举不起来了，不知道是不是伤了筋骨。身上又挨了许多棍子，他深怕自己有骨头断了或者受了内伤，幸好一路走来，还没有异样。
+"I know, but there's nothing we can do now..." Guo Yi was completely exhausted, and his whole body ached. It wasn't just tetanus. He had a cut on his head that should have been stitched up, but for now, he could only clean, disinfect, and bandage it. The saber blow to his shoulder had been blocked by the anti-stab vest, but it hurt so much now that he couldn't even lift his arm. He didn't know if he had injured his muscles or bones. He had also been hit many times with the staves. He was afraid he had broken bones or internal injuries, but fortunately, he hadn't felt anything unusual so far.
 
-　　相形之下，萨琳娜的状况却不大理想。她有一处中箭伤了腿，幸好有护膝的带子挡了一下，入肉不深。但是她在被薛子驮着跑的时候实际上当了肉盾，背上连挨了几棍子，看起来是受了点内伤，问题是她在发烧，大约是感冒引起的。急救包里有退烧药，薛子良用水化开，喂她吃了下去。
+In comparison, Sarlina's condition was not ideal. She had an arrow wound in her leg, but fortunately, it had been deflected by the strap of her knee pad and had not gone in deep. However, she had acted as a human shield while being carried by Xue and had taken several blows to the back. It seemed she had some internal injuries. The problem was that she was running a fever, probably caused by a cold. There was fever medicine in the first-aid kit. Xue Ziliang dissolved it in water and fed it to her.
 
-　　外面鲜淅淅沥沥的下起雨来，石窟很小，萨琳娜躺着，他们的腿就都在外面了，薛子良从背包里翻出防水布给每人盖了一块。
+Outside, it began to rain lightly. The cave was small. With Sarlina lying down, their legs were all outside. Xue Ziliang took out a waterproof tarp from his backpack and covered each of them.
 
-　　郭逸的脑袋疼，心里更是乱成一团。刚才的那一场苦斗，生死攸关之外又给他带来了其他烦恼。这些人无论从衣着还是模样，都是不折不扣的古代人形象，一开始他还抱着怀疑的心态，揪了下死人的发髻，发觉那是真得，并不是头套，再看他们粗劣的衣服、武器，不可能是拍电视的道具——那头领的刀子，就是一把真正的铁家伙，不是机制的钢片刀具。
+Guo Yi's head ached, and his mind was in turmoil. The desperate fight just now, besides being a matter of life and death, had brought him other troubles. These people, from their clothes to their appearance, were unmistakably ancient people. At first, he was skeptical. He had pulled the hair bun of a dead man and found that it was real, not a wig. Looking at their crude clothes and weapons, they couldn't be props for a TV show—the leader's saber was a real iron weapon, not a machine-made steel blade.
 
-　　几个死人身上没什么东西，除了一些铜钱和零碎。小郭掏出来端详了半天，大致看出是“天启通宝”，天启是哪年？他不记得了，就记得天启是崇祯的哥哥，大明的倒数第二代皇帝。几乎每个死人身上都有个小荷包，里面有个弯曲的铁皮，还有块石头和松散的棉絮状的草。郭逸颠来倒去的研究了半天，没看出这是这是啥玩意。
+There was nothing on the dead bodies except for some copper coins and small items. Little Guo took them out and examined them for a long time. He could roughly make out that they were "Tianqi Tongbao." What year was Tianqi? He couldn't remember, only that Tianqi was Chongzhen's older brother, the second-to-last emperor of the Ming Dynasty. Almost every dead person had a small pouch containing a curved piece of iron, a stone, and some loose, cotton-like grass. Guo Yi studied it over and over for a long time but couldn't figure out what it was.
 
-　　“这是火镰。”薛子良凑了过来。
+"It's a fire striker (*huolian*)," Xue Ziliang leaned over.
 
-　　“什么？”
+"What?"
 
-　　“火镰。”他把防水布拉了一拉，“你还是中国人，这是你们祖宗取火的工具。”
+"A fire striker." He pulled the tarp a little. "You're Chinese, and you don't know? This is the tool your ancestors used to make fire."
 
-　　“靠，你祖宗不也是中国人……”郭逸骂了一句，问，“你怎么知道的？”
+"Damn it, aren't your ancestors Chinese too..." Guo Yi cursed, then asked, "How do you know?"
 
-　　“纽约大都会博物馆里有陈列品的，我看过。你看——”薛子良拿过火镰和小石头，左手拿住火石并将火绒压在火石与手指间，右手握紧火镰，将刃部对准火石猛击，碰撞迸发出来许多火星，“我是没练习过，博物馆演示的人打几次就能把把火星引着火绒，很奇妙。”
+"There's a display at the Metropolitan Museum of Art in New York. I've seen it. Look—" Xue Ziliang took the fire striker and the small stone. He held the flint in his left hand, pressing the tinder between the flint and his finger. He held the striker tightly in his right hand and struck the blade against the flint. Many sparks flew out. "I haven't practiced. The person demonstrating at the museum could light the tinder with the sparks after a few strikes. It's amazing."
 
-　　郭逸只觉得一股寒气从背脊上冒了起来。
+Guo Yi only felt a chill run down his spine.
