--- a/_posts/2009-11-4-2-01800.md
+++ b/_posts/2009-11-4-2-01800.md
@@ -1,95 +1,95 @@
 ---
 layout: post
-title: 第十八节 百仞滩（二）
+title: Section 18: Bairen Tan (Part 2)
 category: 2
 path: 2009-11-4-2-01800.md
 tag: [normal]
 ---
 
-　　闲聊起来，才知道这家人自己借船去海南旅游，突然遇到风暴迷航，接着就被抓到了船上。老爷子明秋曾经在海军南海舰队驻海南岛部队服役多年，转业后在在民政部门工作；老太太李梅则在商贸公司当领导多年的——怪不得气度从容说话得体；至于那一直不吭气的儿子明朗，是个安全生产监督部门的公务员。这家人到现在对自己的遭遇还是摸不着头脑。
+Chatting, they learned that this family had chartered a boat for a trip to Hainan, suddenly encountered a storm and got lost, and then were captured and brought onto the ship. The old man, Ming Qiu, had served in the South Sea Fleet of the Navy stationed in Hainan for many years. After being transferred to civilian work, he worked in the civil affairs department. The old lady, Li Mei, had been a leader in a trading company for many years—no wonder she had a calm demeanor and spoke appropriately. As for the son, Ming Lang, who had been silent all along, he was a civil servant in the safety production supervision department. This family still had no clue about their own situation.
 
-　　“那个姓萧的什么委员，一天到晚说什么这里是1628年的临高县，这不瞎掰吗？我们家老头子在海南当海军22年，临高去过不知道多少次……我看他端端正正的一个小伙子，也不像个神经病。”
+"That committee member named Xiao, he keeps saying this is Lingao County in 1628. Isn't that nonsense? Our old man was in the navy in Hainan for 22 years and has been to Lingao countless times... I see he's a decent young man, not like a lunatic."
 
-　　原来和他们一样啊，郭逸想其实我们也是一抹黑。正说着话，一直在河滩上走来走去看石刻发呆的老爷子忽然走了回来，脸色难看极了，双眼呆滞。
+So they were the same as them. Guo Yi thought that they were also in the dark. As they were talking, the old man who had been walking around on the river beach looking at the stone carvings in a daze suddenly walked back, his face extremely ugly, his eyes dull.
 
-　　李梅忙扶着他坐下，看他的模样，慌了起来，这老头子什么时候变得这么失魂落魄了，莫不是荒郊野外中了邪？说起来刚才路上遇到的那些尸体还真透着古怪。
+Li Mei hurriedly helped him sit down. Seeing his appearance, she became flustered. When did this old man become so dispirited? Could he have been possessed by something evil in the wilderness? Speaking of which, the bodies they encountered on the road were indeed strange.
 
-　　问了他半天身体怎么样？明老爷子才抬起头来，说了两个字：
+She asked him for a long time how he was feeling. Only then did Old Man Ming raise his head and say two words:
 
-　　“完了。”
+"It's over."
 
-　　这下可把一家人都给急坏了，老爷子平时性格固执，是个不认输的主，忽然怎么冒出这么一句来？
+This made the whole family anxious. The old man was usually stubborn and never admitted defeat. How could he suddenly say such a thing?
 
-　　“爸，您可别吓我们……”明郎赶紧扶住他爹。
+"Dad, don't scare us..." Ming Lang quickly supported his father.
 
-　　“到底怎么了呀？你这么没头没脑的，要把我吓死啊？”李梅急得直跳脚。
+"What on earth is wrong? You're being so cryptic, you're going to scare me to death!" Li Mei was so anxious she was jumping up and down.
 
-　　“这里，真得是临高！”
+"This place, it really is Lingao!"
 
-　　“什么？！”坐在石头上的另外四个人都惊叫起来。两个ATF特工对临高没概念，一脸莫名其妙地看着他们。
+"What?!" The other four people sitting on the rocks all cried out in alarm. The two ATF agents had no concept of Lingao and looked at them with a puzzled expression.
 
-　　“没错，”明老爷子颤巍巍的指着那块刻着“百仞滩”三个大字的石头，“这里就是临高的百仞滩。”说着他从怀里掏出一个发黄的小相册，翻开里面都是过去的拍得旧照片。
+"That's right," Old Man Ming pointed with a trembling finger at the rock engraved with the three large characters "Bairen Tan." "This is Bairen Tan in Lingao." As he spoke, he took out a yellowed small photo album from his pocket. Inside were old photos taken in the past.
 
-　　“你们看这张！”大家把脑袋凑了过来。照片上，正值中年的明秋一身海军军官的制服，和战友站在一块一模一样的石头旁，那石头上也赫然刻着“百仞滩”三个字！
+"Look at this one!" Everyone craned their necks. In the photo, a middle-aged Ming Qiu in a naval officer's uniform was standing next to an identical rock with a comrade-in-arms. The rock was also impressively engraved with the three characters "Bairen Tan"!
 
-　　“那也没什么，”明郎迟疑的开了口，“不就是到了百仞滩。”
+"That's nothing," Ming Lang said hesitantly. "We've just arrived at Bairen Tan."
 
-　　“你看后面！”老爷子急了起来。
+"Look behind!" the old man said anxiously.
 
-　　大家赶紧再看，照片的背景远处是一道水坝，再抬头看，一模一样的百仞滩刻石背后，却根本没有这道水坝！
+Everyone quickly looked again. In the background of the photo, there was a dam in the distance. Looking up again, behind the identical Bairen Tan carved stone, there was no dam at all!
 
-　　【注：百仞滩刻石正好在水电站的大坝和发电所之间。所以照片里完全可以拍进去】
+[Note: The Bairen Tan carved stone is located between the dam of the hydroelectric power station and the power plant. So it can be fully captured in the photo.]
 
-　　这下所有人的背脊上都在直冒凉气，水坝呢？慕敏说：“现在整治小水电，说不定已经拆了……”
+Now a chill ran down everyone's spine. Where was the dam? Mu Min said, "They're renovating small hydropower stations now, maybe it's been demolished..."
 
-　　“不，不可能的。”老爷子固执的摇着头，“百仞滩水电站一直是临高的主要发电站，怎么会拆掉？我在临高的战友也没说过起过。”
+"No, that's impossible." The old man shook his head stubbornly. "The Bairen Tan hydropower station has always been the main power station in Lingao. How could it be demolished? My comrades-in-arms in Lingao never mentioned it."
 
-　　“也许他忘记说了。”
+"Maybe he forgot to say."
 
-　　“我前几年来过百仞滩，百仞滩周围的环境不是这样！这里本该不远处就有个农场。”老爷子继续说，“但是地形和这里一模一样！水里的石头，还有石刻……”老爷子翻着照片，“在海南当兵的时候，百仞滩我来过至少十次，石刻、怪石我都拍过照……”
+"I came to Bairen Tan a few years ago, and the environment around Bairen Tan was not like this! There should be a farm not far from here," the old man continued. "But the terrain is exactly the same as here! The rocks in the water, and the stone carvings..." The old man flipped through the photos. "When I was a soldier in Hainan, I came to Bairen Tan at least ten times. I've taken pictures of the stone carvings and strange rocks..."
 
-　　“其实从我走到临近滩头起，我就在怀疑了……四周的环境，太奇怪了……”老爷子双手颤抖，“当时我就觉得，这地方我来过，好像和做梦一样。”
+"Actually, from the moment I walked near the beach, I was suspicious... The surrounding environment is too strange..." The old man's hands trembled. "At that time, I felt that I had been to this place before, like in a dream."
 
-　　郭逸抢过相册，一溜烟的下到滩头上去看了。一张一张照片的比对，越比对越心慌，他知道老爷子为什么会失魂落魄了，太邪乎了。除非这世界上会有一模一样的地形，否则根本就无法解释现在的样子，那些照片上的石刻，无论字形、石头的模样，在水里的位置，无论怎么比对，都表明：这是同一个地方。
+Guo Yi snatched the photo album and rushed down to the beach to see. He compared the photos one by one, and the more he compared, the more flustered he became. He knew why the old man was so dispirited. It was too bizarre. Unless there was an identical terrain in the world, there was no way to explain the current situation. The stone carvings in the photos, whether it was the font, the appearance of the stones, or their position in the water, all indicated that this was the same place.
 
-　　如果说真要有什么不同的话，就是这里有照片上没有的东西：河里几块特别的大石头。还有些是照片上有这里却没有的东西：消失的水坝、还有就是某些石刻。他仔细地看了半天，发现了一个可怕的事实：石刻全是清代以前的！而且以明代的石刻最为清晰可辨，风化的痕迹很小。明老的照片上有一副石刻“临江天籁”，字体很大可以看清石刻的上款：“清宣统元年春”。郭逸找到了这块石头，上面却一个字也没有，他不死心，又把自称是痕迹学专家的薛子良叫过来，要他把那些本来该有石刻的石头都鉴定一下，有无磨凿的痕迹。薛子良剔开厚厚的青苔，验看了半天，宣称这些石头从来就没刻过字。
+If there was any difference, it was that there were things here that were not in the photos: a few particularly large rocks in the river. There were also some things that were in the photos but not here: the disappeared dam, and some stone carvings. He looked carefully for a long time and discovered a terrible fact: the stone carvings were all from before the Qing Dynasty! And the Ming Dynasty stone carvings were the most clearly discernible, with very little sign of weathering. There was a stone carving in Old Man Ming's photo that read "Linjiang Tianlai." The font was large enough to see the inscription on the top: "First year of the Xuantong reign of the Qing Dynasty, spring." Guo Yi found this rock, but there was not a single word on it. He didn't give up and called over Xue Ziliang, who claimed to be an expert in traceology, and asked him to examine all the rocks that should have had stone carvings for any signs of grinding or chiseling. Xue Ziliang scraped away the thick moss and examined them for a long time, declaring that these rocks had never been carved.
 
-　　【注：以上石刻，现在的百仞滩上依然可以看到，目前以清代留存为主，明代的已不多见，但是在县志里还可以看到许多当时的石刻纪录】
+[Note: The above stone carvings can still be seen on Bairen Tan today. Currently, they are mainly from the Qing Dynasty, and those from the Ming Dynasty are rare, but many records of the stone carvings at that time can still be found in the county annals.]
 
-　　郭逸回来时候的神情更让大家慌乱，忽的一下子，明家的另外三口人就都下到河滩上去了。一直莫名其妙的两个ATF脸色也难看起来。
+Guo Yi's expression when he returned made everyone even more flustered. Suddenly, the other three members of the Ming family all went down to the river beach. The two ATF agents who had been puzzled all along also looked grim.
 
-　　现在的状况，正应了“进退两难”，没人原意相信这是古代的中国，但是证据却这么的强大，无法用任何理由来假设。到底是继续溯河而上，还是马上返回河口？一群人心里谁都没了底，心里空落落的。
+The current situation was exactly "between a rock and a hard place." No one was willing to believe that this was ancient China, but the evidence was so strong that it couldn't be explained away by any reason. Should they continue up the river or return to the river mouth immediately? No one in the group had a clue, and their hearts were empty.
 
-　　往前走，天知道会遇到什么，袭击有第一次就会有第二次，他们连袭击者是谁、为什么要袭击都不知道。几个人商量了一下，觉得既然到了百仞滩，现在离开临高县城不过4－5公里的路，还是设法去看看为好，别得不说，这几号伤员还是住在人民的医院里比较放心。要是临高没有人民的医院，真得只有县衙门，就只好回博铺了，好歹看这群疯疯癫癫的人没杀人的意思，海滩营地里貌似还有个红十字旗在飘。
+Going forward, who knew what they would encounter. If there was a first attack, there would be a second. They didn't even know who the attackers were or why they were attacking. After some discussion, they felt that since they had reached Bairen Tan and were only 4-5 kilometers away from Lingao County, it was better to try to go and see. Not to mention, it would be more reassuring for the injured to stay in a people's hospital. If there was no people's hospital in Lingao and only a county yamen, they would have to go back to Bopu. At least, it seemed that this group of crazy people had no intention of killing them, and there seemed to be a Red Cross flag flying at the beach camp.
 
-　　当下兵分两路，明老爷子自己、小郭和薛子良一起去临高侦察，其他人暂时留在这里，百仞滩地形复杂，躲藏起来不难。小郭反对说他年龄大了，长途跋涉恐怕会过于操劳，明秋说自己对地形熟悉，是不是临高一看就知道，比他们这样的乱撞好。薛子良担心的却是留守的基本是妇女太危险，明秋说不碍事，他儿子、儿媳都是战力，儿媳是警察不说，这儿子念中学的时候也是经常去提刀砍人的主，街头斗殴经验丰富——小郭对此深表怀疑。
+They decided to split into two groups. Old Man Ming himself, Little Guo, and Xue Ziliang would go to Lingao to scout, while the others would temporarily stay here. The terrain of Bairen Tan was complex, and it was not difficult to hide. Little Guo objected, saying that he was old and the long journey might be too tiring. Ming Qiu said that he was familiar with the terrain and could tell if it was Lingao at a glance, which was better than them bumping around randomly. Xue Ziliang was worried that it would be too dangerous for the women to stay behind. Ming Qiu said it was fine, his son and daughter-in-law were both combatants. Not to mention his daughter-in-law was a police officer, his son was also a master of street fighting with a knife when he was in middle school, and had rich experience in street brawls—Little Guo was deeply skeptical about this.
 
-　　新组成的临高侦察队把行李都留下，每人只带木棍、匕首和少量食品。明秋吩咐自己老婆：“过二个小时我们不回来，你们就赶紧往回走。”这边一家人分离有点伤感，老太太眼泪汪汪起来，直说要他小心别逞强，又千叮咛万嘱托的请二两位男士多照看老爷子，这番说辞大约刺伤了老头的自尊心，居然哼了一声，抬屁股自顾自的就走了。
+The newly formed Lingao reconnaissance team left all their luggage behind, each carrying only a wooden stick, a dagger, and a small amount of food. Ming Qiu instructed his wife, "If we don't come back in two hours, you guys should go back immediately." The family's separation was a bit sad. The old lady's eyes were teary, and she kept telling him to be careful and not to be brave. She also repeatedly asked the two men to take care of the old man. This speech probably hurt the old man's self-esteem. He snorted, got up, and walked away on his own.
 
-　　小郭和薛子良赶紧追了上去，三个人一路跋涉，向县城挺进。
+Little Guo and Xue Ziliang quickly caught up. The three of them trekked all the way, heading for the county town.
 
-　　他们的探险旅程很顺利，一路上明老爷子认出了更多他熟悉的景色，当临高县城的轮廓出现在眼前的时候，明秋看到记忆里从来没有的城墙之后半晌说不出话来。再看到城门外的正在修筑的营寨和蚂蚁般爬上爬下的古代劳动人民，三个人脸色发白，薛子良一屁股坐在地上，双手抱头，在用英文不知道嘀嘀咕咕的说些什么。
+Their expedition was very smooth. Along the way, Old Man Ming recognized more and more familiar scenery. When the outline of Lingao County appeared before them, Ming Qiu was speechless for a long time after seeing the city wall that had never been in his memory. When they saw the camp being built outside the city gate and the ancient laborers crawling up and down like ants, the three of them turned pale. Xue Ziliang sat on the ground, holding his head in his hands, muttering something in English.
 
-　　这么小得可怕的概率，不，应该是根本可能的事情，怎么会落到我头上！为啥不是中二千万彩票！小郭此时和万箭穿心也差不多。
+Such a terrifyingly small probability, no, it should be an impossible thing, how could it fall on me! Why not win the 20 million lottery! Little Guo felt as if he had been pierced by ten thousand arrows.
 
-　　呆立半晌，眼下没什么好讨论的了，赶快回博铺吧。起码在那里还有一群21世纪来的现代人，更重要的是他们都是中国人。薛子良深受刺激，一路上嘀嘀咕咕的用英文自言自语，说个不停。
+After standing there for a long time, there was nothing to discuss. Let's go back to Bopu quickly. At least there was a group of modern people from the 21st century there, and more importantly, they were all Chinese. Xue Ziliang was deeply stimulated and muttered to himself in English all the way.
 
-　　下午13时20分，博铺－百仞滩公路勘测队用电台汇报，在文澜河滩涂上见到上游漂下多具尸体，应该都是当地土著。
+At 13:20 in the afternoon, the Bopu-Bairen Tan highway survey team reported by radio that they had seen several bodies floating down from the upper reaches of the Wenlan River, all of whom should be local natives.
 
-　　下午14：36分，临高城下的侦察队报告，有人带领小股乡勇入城。
+At 14:36 in the afternoon, the reconnaissance team under Lingao City reported that someone was leading a small group of local braves into the city.
 
-　　下午15：02，博铺－百仞滩公路勘测队报告，早晨出发的两拨人狼狈不堪，失魂落魄的回来了，一个劲地喊着要见领导。
+At 15:02, the Bopu-Bairen Tan highway survey team reported that the two groups that had set out in the morning had returned in a sorry state, looking dispirited, and were shouting to see the leader.
 
-　　“小于呀，看来你的计划实现了。”[萧子山][y001]半是恭维半是担忧的对于鄂水说。
+"Little Yu, it seems your plan has been realized," [Xiao Zishan][y001] said to Yu E'shui, half flattering and half worried.
 
-　　“狮屎胜于熊便。”小于波澜不惊，淡淡道，“估计一路上是吃了苦头的。”
+"Lion's shit is better than bear's piss," Little Yu said calmly. "I guess they had a hard time on the road."
 
-　　“萧委员，见他们吗？”[李元元][y007]问。
+"Committee Member Xiao, should we see them?" [Li Yuanyuan][y007] asked.
 
-　　“不见，”[萧子山][y001]的气很粗，“你去接待一下，让他们先安顿下来。对了，通知冉耀，给他们每人发一个临时身份证。”
+"No," [Xiao Zishan][y001] said gruffly. "You go and receive them and let them settle down first. By the way, notify Ran Yao to issue each of them a temporary ID card."
 
-　　“临时身份证？”[李元元][y007]呆了一下，她为执委会办理文案差不多一年了，没听说过还有这玩意。
+"Temporary ID card?" [Li Yuanyuan][y007] was stunned. She had been handling documents for the Executive Committee for almost a year and had never heard of such a thing.
 
-　　“对，临时的，冉耀知道的。他们现在还不是正式的穿越众。”
-[y001]: /characters/y001 "萧子山"
-[y007]: /characters/y007 "李元元"
+"Yes, temporary. Ran Yao knows. They are not yet official transmigrators."
+[y001]: /characters/y001 "Xiao Zishan"
+[y007]: /characters/y007 "Li Yuanyuan"
