--- a/_posts/2009-11-7-2-02100.md
+++ b/_posts/2009-11-7-2-02100.md
@@ -1,101 +1,101 @@
 ---
 layout: post
-title: 第二十一节 筑路（二）
+title: Section 21: Road Construction (Part 2)
 category: 2
 path: 2009-11-7-2-02100.md
 tag: [normal]
 ---
 
-　　更改过筑路计划之后，整个进度就快得多了。[王洛宾][y003]也说到做到，执委会通过人事数据库，把所有开过拖拉机、工程机械和重型汽车经历的人都调集起来，白羽这个准备把拖拉机改装成坦克、农用车改成步兵战车，当上穿越军装甲兵之父的前坦克兵再一次惨遭无差别抓丁，被充实到工程队去了。
+After changing the road construction plan, the whole progress was much faster. [Wang Luobin][y003] also did what he said. The Executive Committee, through the personnel database, mobilized all the people who had experience in driving tractors, construction machinery, and heavy trucks. Bai Yu, a former tank soldier who was preparing to convert tractors into tanks and agricultural vehicles into infantry fighting vehicles to become the father of the armored forces of the Transmigration Army, was once again indiscriminately drafted and assigned to the engineering team.
 
-　　梅晚亲自上阵，巡视着工地，顺便教这些新来的筑路工人一些工具使用方法和土工作业——说来可怜，多数城市宅男连到手里的铁锹都拿不利索，要他们铲个土，挖个沟、耙平地面没一个做得像样的。
+Mei Wan personally went to the front line, inspecting the construction site and teaching these new road construction workers some tool usage methods and earthwork operations—it was pitiful to say that most of the urban otaku couldn't even hold the shovels in their hands properly. Asking them to shovel dirt, dig a ditch, or level the ground, none of them did a decent job.
 
-　　他教了一会，又看了下机械的施工情况。虽然开工程机械的人也不怎么熟练，好歹还能做——幸亏穿越前执委会安排人去学习过。
+He taught for a while and then looked at the construction situation of the machinery. Although the people who drove the construction machinery were not very skilled, they could still do it—fortunately, the Executive Committee had arranged for people to learn before the transmigration.
 
-　　还好有工程机械，梅晚暗自庆幸，否则很难想象这群所谓的施工队员会把活干成什么样子。巡视一遍，忽然看到有个人干活有模有样的，他在工地上当项目经理多年，生手还是熟手一看便知。小伙子看起来壮壮实实的，就是干活有点懒散，动作缓慢。梅晚走了过去，说：
+Fortunately, there was construction machinery. Mei Wan secretly rejoiced. Otherwise, it would be hard to imagine what kind of work this group of so-called construction team members would do. After a round of inspection, he suddenly saw a person who was working in a proper manner. He had been a project manager on construction sites for many years, and he could tell a novice from an expert at a glance. The young man looked strong and sturdy, but he was a bit lazy in his work and his movements were slow. Mei Wan walked over and said:
 
-　　“干得不错啊，上过工地？”
+"You're doing a good job. Have you worked on a construction site before?"
 
-　　“上过，我干过的活可多了。”小伙子歇了下来，“你是梅经理吧？”梅晚过去是工程队的项目经理，于是大家都跟着这么叫了。
+"Yes, I've done a lot of work." The young man stopped to rest. "Are you Manager Mei?" Mei Wan used to be the project manager of the engineering team, so everyone followed suit and called him that.
 
-　　“没错，是我。你认得我？”梅晚有点诧异，这个人他并不认识。
+"That's right, it's me. Do you know me?" Mei Wan was a little surprised. He didn't know this person.
 
-　　“尽快认得领导是我们打工仔的基本能力么，”小伙子笑了起来，“看到领导来了，就得赶紧卖力干活……”
+"Getting to know the leaders as soon as possible is a basic skill for us migrant workers," the young man smiled. "When we see the leader coming, we have to work hard..."
 
-　　梅晚哈哈笑了起来，“你叫什么？”
+Mei Wan laughed out loud. "What's your name?"
 
-　　“谭明。大伙都叫我肥明。”谭明说着又干起活来，“我不但在建筑工地干过，还做过保安、石油工人、网络游戏代练、印刷工……”
+"Tan Ming. Everyone calls me Fei Ming." Tan Ming said and started working again. "I've not only worked on construction sites, but also as a security guard, an oil worker, a power-leveler for online games, and a printer..."
 
-　　“当印刷工人怎么到这儿来了？”
+"How did a printer end up here?"
 
-　　“这不一把年纪了也没混出个样子，如今经济形势不好，又失业。想反正混不出名堂了，干脆换个地儿试试看吧。”
+"I'm getting on in years and haven't made a name for myself. The economy is bad now, and I'm unemployed again. I thought since I can't make a name for myself anyway, I might as well try a different place."
 
-　　梅晚转了一圈，回到帐篷里，他对总体的进度还算满意，施工队长冰风转进了帐篷，向他汇报伙食组刚送来1吨饮用水的水罐，食盐也拨到了。
+Mei Wan walked around and returned to the tent. He was quite satisfied with the overall progress. The construction team leader, Bing Feng, came into the tent and reported to him that the food team had just delivered a 1-ton water tank of drinking water, and the salt had also been allocated.
 
-　　“安全帽还没有吗？”梅晚问。
+"Still no safety helmets?" Mei Wan asked.
 
-　　“王委员刚才说早晨已经派人去砍柳条了，现在正在试制。”
+"Committee Member Wang said this morning that people have been sent to cut willow branches, and they are now being trial-produced."
 
-　　“好，现在不戴问题也不算大，吊装活不多。”他想了下，“对了，队里有个叫谭明的，过去在建筑工地上干过，活很熟，你先安排他当个班组长，看看他有多大能耐，行得话以后培养他当施工员。”
+"Good, it's not a big problem not to wear them now. There isn't much lifting work." He thought for a moment. "By the way, there's a guy named Tan Ming in the team. He's worked on construction sites before and is very skilled. You can arrange for him to be a team leader first and see what he's capable of. If he's good, we can train him to be a construction supervisor in the future."
 
-　　“好的，我这就安排。”冰风正要出去，梅晚叫住了他，“以后这类事情你自己要多看着点，有合适的人就培养。你一个结构工程师，又是副组长，老在工地上当工头怎么行？不浪费么。”
+"Okay, I'll arrange it right away." Bing Feng was about to go out when Mei Wan called him back. "You need to pay more attention to this kind of thing in the future and cultivate suitable people. You are a structural engineer and a deputy team leader. How can you always be a foreman on the construction site? Isn't that a waste?"
 
-　　冰风有点摸不着头脑的，没闹明白这话什么意思，胡乱应了几句就出去了。
+Bing Feng was a little confused and didn't understand what he meant. He mumbled a few words and went out.
 
-　　梅晚点上一支烟，心里有些混乱，按理说他的心思应该都在这条公路上，但是昨天会议上的情景还是不断重现在脑海里。没料到卓天敏这个一贯低调的人居然当场给他来了这一手。这是在博出位啊。梅晚有点苦涩的想到：卓天敏的建筑师、咨询师资格证书恐怕引起执委会很大的兴趣……
+Mei Wan lit a cigarette, his mind in a bit of a mess. Logically, his thoughts should be on this highway, but the scene from yesterday's meeting kept replaying in his mind. He didn't expect that Zhuo Tianmin, who had always been low-key, would pull such a move on him on the spot. This was a bid for the spotlight. Mei Wan thought a little bitterly: Zhuo Tianmin's architect and consultant qualification certificates would probably arouse great interest from the Executive Committee...
 
-　　一时间他觉得危机感四伏，本来他对建筑工程组的这个班子十分满意，冰风这个副组长是结构工程师，专业比较偏；小燕是个杂家，博而不精；[李潇侣][y156]虽然业务水平很高，但是是女人，又一脸对什么都不感兴趣的模样。
+For a moment, he felt a sense of crisis. He had been very satisfied with the team of the construction engineering group. Bing Feng, the deputy team leader, was a structural engineer with a relatively specialized field; Xiao Yan was a jack-of-all-trades, but master of none; although [Li Xiaolü][y156] had a high level of professional skill, she was a woman and looked uninterested in everything.
 
-　　但现在不同了，虽然他自认对土木工程的管理和协调有丰富的经验，但是论及专业水准，他显然不是这个男人的对手。
+But now it was different. Although he considered himself to have rich experience in the management and coordination of civil engineering, in terms of professional standards, he was obviously no match for this man.
 
-　　正胡思乱想着，步话机里汇报，一号标段的3公里路基工作已经结束，现在路面摊设队要进场了，但是路面材料还没确定。梅晚揣上个本子，顺手操起个小铲子，出帐篷沿着取土的路沟不断的铲起一铲土，用眼睛看，用手捏搓，接着又在小本子上记点什么，就这么走了一米又一米，把个正测量文澜河水文资料的燕雀志看得莫名其妙。
+As he was lost in thought, the walkie-talkie reported that the 3-kilometer roadbed work of the first section had been completed. Now the road surface paving team was about to enter the site, but the road surface material had not yet been determined. Mei Wan put a notebook in his pocket, picked up a small shovel, and went out of the tent. He continuously shoveled up a shovelful of soil along the road ditch where the soil was being taken, looked at it with his eyes, kneaded it with his hands, and then wrote something in his small notebook. He walked meter after meter like this, which made Yan Quezhi, who was measuring the hydrological data of the Wenlan River, very confused.
 
-　　“梅经理，你踅摸什么呢？”
+"Manager Mei, what are you looking for?"
 
-　　“看土质。”梅晚随手把手里的土搓碎，“找适合铺路面的土。”
+"Looking at the soil quality." Mei Wan crushed the soil in his hand. "Looking for soil suitable for paving the road."
 
-　　“挖出这么多土不能用？路基不也是这么填得。”
+"Can't we use so much excavated soil? Isn't the roadbed filled like this?"
 
-　　“路基用土要求比路面简单。”梅晚解释说土壤按颗粒大小可分为粘土、砂土和粉砂土，自然界的土壤一般都是三者的混合体，按其含量的不同，又可细分成九种，用来修筑路面各有不同的特性，有的很适合，有的完全不能用，有的则需要改性处理。
+"The requirements for the soil used for the roadbed are simpler than for the road surface." Mei Wan explained that soil can be divided into clay, sand, and silt according to the particle size. The soil in nature is generally a mixture of the three. According to their different contents, they can be subdivided into nine types. They have different characteristics when used to build road surfaces. Some are very suitable, some are completely unusable, and some require modification treatment.
 
-　　“简易公路是土质路面，比起常见的硬化路面来有很多的缺点，比如扬尘量大、路面承受力小，下雨天路面会软化，形成水坑泥泞……”他说，“所以选择和加工路面用土是很要紧的环节，用好了，这类问题就会小一些，少一些。”
+"A simple highway is a dirt road surface. Compared with the common hardened road surface, it has many shortcomings, such as large amount of dust, small road surface bearing capacity, and the road surface will soften on rainy days, forming puddles and mud..." he said. "So choosing and processing the road surface soil is a very important link. If it is used well, these problems will be smaller and fewer."
 
-　　“就比如说这种砂土吧，这里沿河，砂土很多。”说着他铲起一铲土，“这个土的特点是几乎都沙粒，粘性小，干的时候松散不成型，潮湿的时候也捏塑不起来。拿这个土铺设出来的路面，晴天干燥的时候行车很容易形成深车辙，雨天又有微弱的粘性，优点是路面容易干，掺入一定的粘土改性之后才能用来铺筑路面。”
+"For example, this sandy soil, there is a lot of sandy soil along the river here." As he spoke, he shoveled up a shovelful of soil. "The characteristic of this soil is that it is almost all sand particles, with little stickiness. It is loose and unformed when dry, and cannot be molded when wet. The road surface paved with this soil is prone to deep ruts when driving on a dry sunny day, and has a slight stickiness on rainy days. The advantage is that the road surface is easy to dry. It can only be used to pave the road surface after being mixed with a certain amount of clay for modification."
 
-　　“这种呢？”燕雀志对这个问题很感兴趣，看到那边的泥土不一样，赶紧捏了一点过来，“按这样的说法，是这种粘土和砂土混合的土壤最适合铺路了。”
+"What about this one?" Yan Quezhi was very interested in this question. Seeing that the soil over there was different, he quickly pinched a little and brought it over. "According to this, this kind of soil mixed with clay and sand is the most suitable for paving roads."
 
-　　“理论上的确是这样，但是实际又没那么简单。各种土壤多一点少一点都有不同的特性。”梅晚边说边把泥土拿到手里端详了一下，又把它搓了一下，泥土变成了细细短短的小土条，“你拿来的这种是细砂质垆坶，它即有粘土又含有比较多的细砂，所以有些粘性，这种土就比较适合筑路面。”
+"Theoretically, that's true, but in reality, it's not that simple. Different proportions of various soils have different characteristics." Mei Wan said as he took the soil in his hand and looked at it, then rubbed it, and the soil turned into fine and short small soil strips. "The one you brought is fine sandy loam. It has both clay and a relatively large amount of fine sand, so it has some stickiness. This kind of soil is more suitable for building road surfaces."
 
-　　“那就是用这种土了？”
+"So we'll use this kind of soil?"
 
-　　“我想找的砂质垆坶，”梅晚拍了下手，“和这种差不多，但是砂粒要粗一些。用这个土铺路的话，经过压实后能保持一顶的密实性，不易松散，行车时尘土较少，雨天不粘车轮，雨后干得快，维护起来容易保持路面的平坦。”
+"I'm looking for sandy loam," Mei Wan clapped his hands. "It's similar to this, but the sand particles are coarser. If you use this soil to pave the road, it can maintain a certain degree of compactness after compaction, is not easy to loosen, has less dust when driving, does not stick to the wheels on rainy days, dries quickly after rain, and is easy to maintain a flat road surface."
 
-　　“那哪看得出啊，砂子细还是粗，这个眼睛看得出来吗？”燕雀志端详了半天手里的泥土。
+"How can you tell? Can you see whether the sand is fine or coarse with your eyes?" Yan Quezhi looked at the soil in his hand for a long time.
 
-　　“仔细看是看得出来的。”梅晚继续指导他，“简单的鉴别方法是用手搓，像你给我的细砂质垆坶，能用手搓成细短的土条，但是砂质垆坶就搓不出来。”
+"You can see it if you look carefully." Mei Wan continued to guide him. "A simple identification method is to rub it with your hands. Like the fine sandy loam you gave me, you can rub it into fine and short soil strips with your hands, but you can't do that with sandy loam."
+	
+"I see." Yan Quezhi was now completely in awe of him. "Professional enough!"
 
-　　“是这样。”燕雀志对此刻对他简直五体投地起来了，“够专业！”
+"Hehe," Mei Wan smiled triumphantly. "Not at all." He thought to himself that the old textbook was indeed very powerful.
 
-　　“呵呵，”梅晚得意地笑了起来，“哪里哪里。”心里想老教科书果然是很有威力的。
+It didn't take long for Mei Wan and Yan Quezhi to find a place to get sandy loam. Of course, if they couldn't find such an ideal material, Mei Wan could also do modification treatment according to the soil conditions, but that would require an extra process and the labor intensity would be much greater.
 
-　　没用多久，梅晚就和燕雀志就发现了一处砂质垆坶的取土地点。当然找不到的这样理想材料的话，梅晚也可以根据土壤条件做改性处理，只是这样的话要多一道工序，劳动强度也大的多。
+The paving of the road surface was personally directed by Mei Wan. Because the traffic volume of the simple highway was not large, it was not necessary to build a very thick road surface. A thickness of 15 cm and two to three passes of a road roller were basically enough. The middle of the road surface was slightly raised to facilitate drainage.
 
-　　路面的摊铺工作由梅晚亲自指挥。简易公路因为交通量不大，没必要修筑很厚的路面，15厘米的厚度再施以2－3次压路机压实就已经基本完工了，路面中间微微隆起，便于排水。
+In order to improve the strength of the road surface, the engineering team mixed a part of the pebbles into the road surface soil. Because the suitable stones were limited, the effect could not be compared with a real gravel road. In other words, it was best for cars not to drive on rainy days.
 
-　　为了提高路面的强度，工程队在路面土里掺入了一部分鹅卵石。因为合适的石头有限，效果还不能很真正的砾石路面相提并论。换句话说，雨天汽车最好还是不要行驶。
+"As soon as possible, as soon as possible, get this thing out as soon as possible." Mei Wan looked at the completed section of the road, threw the cigarette butt on the ground, and stomped on it fiercely.
 
-　　“尽快尽快，尽快出这么个玩意。”梅晚看着完成的路段，把烟头丢到了地上，狠狠的踩了一脚。
+Just after the first watch, the courtyard of the county yamen was very quiet. Only two yamen runners on duty carried small white paper lanterns and walked around the courtyard at intervals, beating the watch with a wooden clapper.
 
-　　刚刚一更过后，县衙的院子里显得十分寂静，只有两个值更的皂隶提着小小的白纸灯笼，每隔一阵在院中各处行走，用木梆打更。
+More than a dozen local braves were sitting or lying in the courtyard. If it were normal times, this official yamen would not tolerate such impudence from this group of bumpkins, but now that the city's defense was tight, and these dozen or so local braves had just fought with the sea pirates yesterday, the yamen runners turned a blind eye and did not disturb them.
 
-　　院中或坐或躺着是十多名乡勇，若是平时，这官衙重地是容不得这群泥腿蛮子如此放肆，但是眼下城防吃紧，这十多名乡勇又是昨天刚和海贼厮杀过的，衙役们也就睁一眼闭一眼的不去叨扰了。
+The one who brought the local braves was Huang Shoutong, the head of Namei Village. He was in his fifties, with a burly figure, vigorous energy, a short, slightly gray beard, a broad forehead, and his eyes flashed like lightning when he opened and closed them. He was a large grain household in the county. His ancestors had followed the army at the beginning of the dynasty and settled in Lingao. Several of his ancestors had passed the imperial examination and changed their civil registration, and the clan had prospered since then. He was generous and righteous and had a high reputation in the village and clan.
 
-　　带乡勇来的，是那美村的首户的黄守统，年在五十上下，身材魁梧，精力健旺，短短的胡须有些花白，眉阔额广，双目开阖闪闪如电。他是本县的一个大粮户，祖辈在国初从征，落户在临高，祖上中过几个秀才改了民籍，宗族就此发达起来。为人慷慨好义在乡里宗族里都很有威望。
+Lingao had always been harassed by pirates, and the local area was not peaceful. Since the Jiajing reign, in order to defend against the wokou, his ancestors had built earthen forts and trained local braves in Namei Village. It was a famous "hard ground" in Lingao. In his generation, with Namei Village as the head, the six nearby villages were jointly guaranteed by the village compact. They could mobilize five or six hundred local braves at any time. Every time they sent troops to suppress bandits or defend the county town, Huang Shoutong would lead the local braves to participate, contributing a lot, and was highly praised by Wu Mingjin.
 
-　　临高历来受海盗的袭扰，地方的也不平靖。从嘉靖年为防御倭寇起，他家祖辈就在那美村筑土寨，练乡勇，是临高有名的“硬地”。到他这代，以那美村为首，临近六村乡约联保，随时可出动五六百乡勇，每次出兵剿匪或是守御县城，黄守统都带乡勇参加，出力很多，很受吴明晋的嘉奖。
+Huang Shoutong was a commoner, but he had a son who was a xiucai and was studying in the county school. This time, when the gentry were invited to a meeting, he was arranging defenses in various villages and only let his son in the county school attend. He also sent more than a dozen local braves with a cart of grain, rice, and vegetables to the city to assist in the defense. Now that this old man suddenly came to visit with his men, Wu Mingjin was both surprised and delighted. After the host and guest sat down in the flower hall and exchanged some pleasantries, Wu Mingjin saw that the old man's net scarf had been changed to white and his eyes were red. He was greatly surprised. He knew that Huang Dahuhu's parents had both passed away. Could it be that his old wife had also recently died of illness?
 
-　　黄守统是个白身，但是有一个儿子是秀才就在县学念书，这次请士绅们来会议的时候，他自己在各村布置防务，只让县学里的儿子来参加，又派了十多名乡勇带着一车粮米菜蔬进城协守。现在这老头突然带人来访，吴明晋又觉诧异，又觉欣喜，宾主到花厅中坐下以后，略作寒暄，吴明晋眼见这老头的网巾换成了白色，双眼通红。大为诧异，他知道黄大户的父母均已去世，难道他的老妻也新病故了？
-
-　　见知县满面诧异，黄守统才告诉他：自己的一个儿子昨天袭击海贼的时候阵亡了。
-[y003]: /characters/y003 "王洛宾"
-[y156]: /characters/y156 "李潇侣"
+Seeing the magistrate's surprised face, Huang Shoutong told him that one of his sons had been killed in action yesterday while attacking the sea pirates.
+[y003]: /characters/y003 "Wang Luobin"
+[y156]: /characters/y156 "Li Xiaolü"
