--- a/_posts/2009-8-29-0-01000.md
+++ b/_posts/2009-8-29-0-01000.md
@@ -1,43 +1,42 @@
 ---
 layout: post
-title: 书评
+title: Book Review
 category: 0
 path: 2009-8-29-0-01000.md
 tag: [normal]
 ---
 
-　　[我是大鲨鱼]
+[I Am a Big Shark]
 
-　　评全书：
+**Review of the entire book:**
 
-　　这本书很好，好就好在有斗争。几百个娃娃丢在一个岛上好几年，也搞出很不小的名堂。跟明政府要斗争，跟海盗要斗争，娃娃们自己内部也要斗争。这些都没有回避，都写出来，而且写得很生动。有斗争就有人爱看，我就爱看。我看年轻人也会爱看，要鼓励他们看，鼓励他们学习斗争。
+This book is very good. It is good because it has struggle. A few hundred young people are thrown onto an island for several years, and they manage to create quite a stir. They have to struggle against the Ming government, struggle against pirates, and the young people themselves have to struggle internally. None of this is avoided; it is all written out, and written very vividly. Where there is struggle, there are people who love to read about it. I love to read about it. I think young people will also love to read it. We should encourage them to read it, encourage them to learn to struggle.
 
-　　娃娃们的斗争也不是书生意气，不是绣花做文章。他们也晓得要有枪杆子，要有粮有钢。要上科学技术，气要多钢更要多，几十几百吨不够，几千上万吨够不够？我看也是不够的。一千一百万吨只怕也不够。我们57年搞了一千一百万吨，也是不够。有人至今不高兴，怕东怕西，像个小脚老太太，走路一摆一摆，摆着摆着就摆到右边去了。还没有掉进沟里面，还差一点。还不如娃娃们。要让娃娃们教育老太太，不教育，总是没有出路。
+The young people's struggle is not just scholarly idealism, not just embroidering an essay. They also know they need to have guns, grain, and steel. They need to use science and technology. They need more gas and even more steel. A few dozen or a few hundred tons is not enough. Are a few thousand or tens of thousands of tons enough? I think that is not enough either. Eleven million tons is probably not enough either. We produced eleven million tons in '57, and it was not enough. Some people are still unhappy about it to this day, afraid of this and that, like a little-footed old lady, swaying as she walks, swaying and swaying until she sways to the right. She hasn't fallen into the ditch yet, but she's close. She's not even as good as the young people. We need to let the young people educate the old lady. Without education, there is no way out.
 
-　　有同志提出来，书里面有些低级趣味，女仆革命什么的，总之是不好，不能让人看，看了要学坏。我就不怕。要允许年轻人犯错误。剥削阶级的尾巴哪有那么容易割干净？总是在哪里缩着，一不小心又会伸出来。跑到明朝那个环境里面，那是个什么环境啊？大地主跟文人们联合欺压老百姓，老百姓的觉悟又还没有那么高，那就没有斗争的压力，压力还没有那么大。这样的环境里面，好人也学坏了。归根结底还是斗争不够。
+Some comrades have pointed out that there are some low-class tastes in the book, the Maid Revolution and what not. In short, it is not good, and people should not be allowed to read it, lest they learn bad things. I am not afraid. We must allow young people to make mistakes. How can the tail of the exploiting class be cut off so easily? It is always shrinking somewhere, and if you are not careful, it will stick out again. They ran into the environment of the Ming Dynasty. What kind of environment was that? The great landlords and the literati united to oppress the common people, and the consciousness of the common people was not yet so high, so there was no pressure from struggle, the pressure was not yet so great. In such an environment, even good people learn to be bad. In the final analysis, it is still a matter of insufficient struggle.
 
-　　书里有个姬信，搞了个什么土著权益保护协会，搞这个没有用。我们那里有句话，叫做脱了裤子放屁，多此一举。这个保护协会就是多此一举。土著的权益要你们元老保护什么呢？总要靠自己，哪里有压迫哪里就有反抗，有了觉悟就要斗争，斗争起来，权益自然就过来了。不斗争总是一点都没得。说是女仆革命，我看是主人分赃。真正要是女仆起来革命了，元老们肯定要镇压的，你姬信也要去镇压，不去不行。这个就是阶级斗争了，总是不以人的意志为转移的。
+There is a Ji Xin in the book who started some kind of native rights protection association. There is no use in doing this. We have a saying where I come from, called "taking off your pants to fart—an unnecessary act." This protection association is an unnecessary act. What do the rights of the natives need you Elders to protect? They must rely on themselves. Where there is oppression, there is resistance. Once they have consciousness, they must struggle. Once they struggle, their rights will naturally come. Without struggle, they will get nothing at all. They call it the Maid Revolution, but I see it as the masters dividing the spoils. If the maids were to truly rise up in revolution, the Elders would definitely suppress them. You, Ji Xin, would also have to go and suppress them; you would have no choice. This is class struggle; it is not subject to human will.
 
-　　也有同志说，这个书是反党，书里一帮人，喊的口号都是抄的共产党，做的事情说穿了还是剥削，还是压迫，还是要当老爷。所以影响就很坏，不能让老百姓看到，看到了会不相信我们共产党。
+Some comrades also say that this book is anti-Party. The group of people in the book, the slogans they shout are all copied from the Communist Party, but what they do, to put it bluntly, is still exploitation, still oppression, they still want to be masters. So the influence is very bad, and the common people cannot be allowed to see it. If they see it, they will not believe in our Communist Party.
 
-　　我想请问党内各位同志，你们是相信人民呢，还是害怕人民呢？我们共产党员不应该害怕人民。古往今来，人民是最有智慧的人，比任何帝王将相都要聪明。在人民群众的面前，耍小聪明，吹牛皮，都是行不通的，是骗不倒人民的。蒋介石也有很多很好听的口号，好多个岳武穆什么的，最后还是不管用，总是不管用。人民一看，你们搞的那个金圆券，那个五子登科，还要打内战，马上就明白了，就不上当了。归根结底还是要看你做了什么。
+I would like to ask all the comrades in the Party, do you believe in the people, or are you afraid of the people? We Communists should not be afraid of the people. Throughout history, the people have been the wisest, smarter than any emperor, king, general, or minister. In front of the masses of the people, playing petty tricks and bragging are all useless; you cannot deceive the people. Chiang Kai-shek also had many nice-sounding slogans, many Yue Wumus and what not, but in the end, it was still useless, always useless. The people took one look at your Gold Yuan currency, your "Five Sons Ascending to Office" (nepotism), and your desire to fight a civil war, and they immediately understood and were not fooled. In the final analysis, it still depends on what you do.
 
-　　我们共产党的干部，凭什么就这么有信心，相信人民会一直信任我们呢？就靠我们口号喊得震天响吗？我是不信的。如果你嘴里说的是一套，做出来又是另外一套，你要去剥削压迫人民，你要去当老爷，那你就是假共产党，人民当然不跟你走。49年是人民跟着你走，把蒋介石送去了台湾，以后要不跟你走了呢？那一样会送你出去。送不去台湾，我看送去海南岛也蛮好。那这个共产党就还不如蒋介石了，连几百个娃娃都不如，娃娃们还有一条大船，假共产党连条裤头子都没有。人民送你光着屁股上路。
+On what basis are we, the cadres of the Communist Party, so confident that the people will always trust us? Is it just because our slogans are earth-shattering? I don't believe it. If you say one thing and do another, if you want to exploit and oppress the people, if you want to be masters, then you are a fake Communist, and the people will certainly not follow you. In '49, the people followed you and sent Chiang Kai-shek to Taiwan. What if they don't follow you in the future? They will send you out just the same. If they can't send you to Taiwan, I think sending you to Hainan Island would be quite good. Then this Communist Party would be even worse than Chiang Kai-shek, not even as good as a few hundred young people. The young people still have a big ship; the fake Communists don't even have a pair of underpants. The people will send you on your way naked.
 
-　　所以我是不怕这个书的。不但我不怕，我还要推荐党内更多的同志来读这本书，要认真读。人民群众愿意读的话就更好，要请更多人民群众一起来读。要让人民群众懂得，假共产党也会喊口号，甚至还会给些甜头，会给些流通券，给些肥料和种子，但是最后他们总还是想着要当老爷，要当压迫者。只有对他们进行坚决的斗争。要把假共产党打倒下去，还要帮助那些真共产党提高觉悟。我对我们这个党还是有信心的，我们中间百分之九十五的同志是真共产党，至少可以改造成真共产党。但是我们绝不能害怕人民，脱离群众。必须要诚心诚意地相信人民群众，向人民群众学习，依靠人民来改造我们的党，我们的党才有希望，我们的事业才有希望。
+So I am not afraid of this book. Not only am I not afraid, I will also recommend that more comrades in the Party read this book, and read it seriously. It would be even better if the masses of the people are willing to read it. We should invite more of the masses to read it together. We must let the masses understand that fake Communists can also shout slogans, and may even give some small favors, some circulation coupons, some fertilizer and seeds, but in the end, they are still thinking about being masters, about being oppressors. We must carry out a resolute struggle against them. We must overthrow the fake Communists, and also help those true Communists to raise their consciousness. I still have confidence in our Party. Ninety-five percent of the comrades among us are true Communists, or at least can be transformed into true Communists. But we must never be afraid of the people or detach ourselves from the masses. We must sincerely believe in the masses of the people, learn from the masses of the people, and rely on the people to transform our Party. Only then will our Party have hope, and our cause have hope.
 
-　　前途是光明的，道路是曲折的。总是这两句话。
+The future is bright; the road is tortuous. It is always these two sentences.
 
-　　
 
-　　[北朝]
+[North Dynasty]
 
-　　阶级斗争不能停，我们之中有些大右派，他们不是通过发动人民，武装人民，进行阶级斗争来推动历史的前进。而是迷信于天上掉下来的恩赐，过去是神仙皇帝，现在是英美帝国主义，未来是火星人，是宇宙虫洞的时间旅行。
+Class struggle cannot stop. There are some great rightists among us. They do not push history forward by mobilizing the people, arming the people, and carrying out class struggle. Instead, they are superstitious about gifts falling from heaven. In the past, it was gods and emperors; now, it is Anglo-American imperialism; in the future, it will be Martians, or time travel through cosmic wormholes.
 
-　　这个最根本的出发点错误了，所以他们尽管有一些抱负，有一些能力，不是去做正确的有利于人民的事情，而是逃避现实现实世界，去往一个比自己更烂的地方，在山中无老虎的小人国里猴子称大王。
+This most fundamental starting point is wrong. Therefore, although they have some ambitions and some abilities, they do not do things that are correctly beneficial to the people. Instead, they escape the real world and go to a place worse than their own, to be the king of the monkeys in a country of dwarfs where there are no tigers.
 
-　　在那个小人国里，不用触动自身利益的情况下，他们倒是可以学着我们做一些有利于人民的事情，比如蒋介石在台湾就搞了土地改革，但是他们的宗旨还是旧的一套，500个大右派试图千年万年的统治一个世界，赤裸裸的奴役压迫世界群众。在他们之中，夺权和反夺权也无时无刻不在上演，文、马的内讧、依靠打法律牌的马甲上位，民意代表乔良的崛起，都是这样。
+In that country of dwarfs, without touching their own interests, they can learn from us and do some things that are beneficial to the people. For example, Chiang Kai-shek carried out land reform in Taiwan. But their purpose is still the old set. 500 great rightists are trying to rule a world for thousands and tens of thousands of years, nakedly enslaving and oppressing the masses of the world. Among them, the seizure of power and the counter-seizure of power are also happening at all times. The internal strife between Wen and Ma, the rise of Ma Jia who relies on playing the legal card, the rise of the people's representative Qiao Liang, are all like this.
 
-　　这是一部揭露了野心家，走资派，工贼，右派，反动学术权威真面目的活话剧和好教材。
+This is a living drama and a good textbook that exposes the true faces of careerists, capitalist-roaders, scabs, rightists, and reactionary academic authorities.
 
-　　值得我们党好好的学习。
+It is worthy of our Party's careful study.
