--- a/_posts/2009-8-31-0-01200.md
+++ b/_posts/2009-8-31-0-01200.md
@@ -1,119 +1,119 @@
 ---
 layout: post
-title: 《临高启明》中的船
+title: Ships in "Lingao Qiming"
 category: 0
 path: 2009-8-31-0-01200.md
 tag: [normal]
 ---
 
-1、“圣船”---丰城轮
+1.  **"Holy Ship" --- Fengcheng**
 
-![丰城轮]({{ site.img_url }}/6d62f624b899a90176973dd91d950a7b0308f515.jpg)
+    ![Fengcheng]({{ site.img_url }}/6d62f624b899a90176973dd91d950a7b0308f515.jpg)
 
-“丰城”型中型杂货船,1971年和1972年上海远洋运输公司在波兰利用国家贸易货款建造的中型杂货船。“丰城”类船登记总吨6557.89吨。净吨3608.3吨。载重吨7167吨。载货6000吨。船舶总长135.26米，宽17.74米。型深10.4米，满载吃水7.65米。空船吃水：艏部0.85米。艉部5.9米。营运航速15节。全船5个货舱。策一、二、三、五舱装干杂货，舱容积8534.70立方米。第四舱为冷冻货舱，分隔为3层，装载冷冻货物，舱容积为1401.4立方米。第一、五舱最底层为植物油舱，装载散装植物油。舱容积815.5立方米。
+    The "Fengcheng" class was a medium-sized cargo ship built for the Shanghai Ocean Shipping Company in Poland in 1971 and 1972, using national trade loans. The "Fengcheng" class ships had a registered gross tonnage of 6557.89 tons, a net tonnage of 3608.3 tons, and a deadweight tonnage of 7167 tons, with a cargo capacity of 6000 tons. The ship's overall length was 135.26 meters, with a beam of 17.74 meters. Its molded depth was 10.4 meters, and its full load draft was 7.65 meters. The empty ship's draft was 0.85 meters at the bow and 5.9 meters at the stern. Its operational speed was 15 knots. The ship had 5 cargo holds. Holds 1, 2, 3, and 5 were for dry general cargo, with a capacity of 8534.70 cubic meters. Hold 4 was a refrigerated cargo hold, divided into 3 levels for frozen goods, with a capacity of 1401.4 cubic meters. The bottom-most level of holds 1 and 5 were for vegetable oil, with a capacity of 815.5 cubic meters.
 
-2、多功能登陆艇
+2.  **Multi-functional Landing Craft**
 
-![多功能登陆艇]({{ site.img_url }}/f39926dbb6fd526628035dfbab18972bd5073683.jpg)
+    ![Multi-functional Landing Craft]({{ site.img_url }}/f39926dbb6fd526628035dfbab18972bd5073683.jpg)
 
-“玉青”级多功能登陆艇是传统的前平板设计，可以装载150名士兵和1台车辆。艇上装备有双联14.5毫米高射机枪，动力系统为2台12V150C柴油机，功率600马力。 
-主要性能参数：艇长24.8米，艇宽5.2米，吃水1.4米；标准排水量58吨，满载排水量85吨；最大速度11.5节，续航力600海里；编制人员10名。
+    The "Yuqing" class multi-functional landing craft has a traditional flat-front design and can carry 150 soldiers and 1 vehicle. The craft is armed with a twin 14.5mm anti-aircraft machine gun. Its power system consists of 2 12V150C diesel engines, with a power output of 600 horsepower.
+    Main performance parameters: Length 24.8 meters, beam 5.2 meters, draft 1.4 meters; standard displacement 58 tons, full load displacement 85 tons; maximum speed 11.5 knots, range 600 nautical miles; crew of 10.
 
-3、自航甲板驳船
+3.  **Self-propelled Deck Barge**
 
-![自航甲板驳船]({{ site.img_url }}/43ffd4ef76094b363daf7a02a3cc7cd98c109df6.jpg)
+    ![Self-propelled Deck Barge]({{ site.img_url }}/43ffd4ef76094b363daf7a02a3cc7cd98c109df6.jpg)
 
-实际载重：1500吨，总吨：1411吨，净吨：342吨，总长：61米，型宽：13.6米，型深：3.2米，吃水：1.8米，适航区域：沿海航区，主机功率：330KW。
+    Actual deadweight: 1500 tons, Gross tonnage: 1411 tons, Net tonnage: 342 tons, Overall length: 61 meters, Molded beam: 13.6 meters, Molded depth: 3.2 meters, Draft: 1.8 meters, Navigation area: Coastal, Main engine power: 330KW.
 
-4、8154“巡洋舰”
+4.  **8154 "Cruiser"**
 
-![8154“巡洋舰”]({{ site.img_url }}/luweiyu3758.jpg)
+    ![8154 "Cruiser"]({{ site.img_url }}/luweiyu3758.jpg)
 
-8154型艉滑道冷冻拖网渔船,是我国远洋捕捞渔船的主力船只,其主要技术数据:柱间长38m,船宽7.6m、船深3.8m,主机功率441kw,排水量431吨,船速12节。
+    The Type 8154 stern trawler is the main vessel of our country's ocean-going fishing fleet. Its main technical data: Length between perpendiculars 38m, beam 7.6m, depth 3.8m, main engine power 441kw, displacement 431 tons, speed 12 knots.
 
-5、飞云号游艇
+5.  **Feiyun Yacht**
 
-![飞云号游艇]({{ site.img_url }}/f44a297adab44aed0559df0bb31c8701a08bfb98.jpg)
+    ![Feiyun Yacht]({{ site.img_url }}/f44a297adab44aed0559df0bb31c8701a08bfb98.jpg)
 
-6、明家乘坐的“海用摩托艇”
+6.  **The Ming Family's "Sea Motorboat"**
 
-![明家乘坐的“海用摩托艇”]({{ site.img_url }}/626a4c43fbf2b2111323e4a1ca8065380dd78ea6.jpg)
+    ![The Ming Family's "Sea Motorboat"]({{ site.img_url }}/626a4c43fbf2b2111323e4a1ca8065380dd78ea6.jpg)
 
-7、兰度的走私船
+7.  **Lando's Smuggling Ship**
 
-![兰度的走私船]({{ site.img_url }}/85518e8fa0ec08fa1d43724859ee3d6d54fbda74.jpg)
+    ![Lando's Smuggling Ship]({{ site.img_url }}/85518e8fa0ec08fa1d43724859ee3d6d54fbda74.jpg)
 
-美式小型金枪鱼围网船
+    American-style small tuna purse seiner.
 
-8、“斯卡伯罗伯爵夫人号”西班牙大帆船
+8.  **"Countess of Scarborough" Spanish Galleon**
 
-![“斯卡伯罗伯爵夫人号”西班牙大帆船]({{ site.img_url }}/6987b26eddc451da754f6d04b6fd5266d1163272.jpg)
+    ![“Countess of Scarborough” Spanish Galleon]({{ site.img_url }}/6987b26eddc451da754f6d04b6fd5266d1163272.jpg)
 
-原型：圣弗朗西斯科号西班牙大帆船。又被称作“无敌号”，该船建于1607年，全长55米，高46米，宽12米，装配有能抵抗三桅战舰的枪炮，能越洋航行，最显著的特点是高耸的船艏和艉楼，“无敌号”配有32门大炮，50磅炮弹，射程达400米。
+    Prototype: The Spanish galleon San Francisco. Also known as the "Invincible," this ship was built in 1607, with a length of 55 meters, a height of 46 meters, and a beam of 12 meters. It was equipped with cannons capable of resisting a three-masted warship and could sail across oceans. Its most distinctive features were its high forecastle and sterncastle. The "Invincible" was equipped with 32 cannons, firing 50-pound cannonballs with a range of 400 meters.
 
-9、李丝雅的“杭州号”单桅纵帆船
+9.  **Li Siya's "Hangzhou" Sloop**
 
-![李丝雅的“杭州号”单桅纵帆船]({{ site.img_url }}/235dc6f9d72a60594e0081f52834349b023bba9b.jpg)
+    ![Li Siya's "Hangzhou" Sloop]({{ site.img_url }}/235dc6f9d72a60594e0081f52834349b023bba9b.jpg)
 
-吃水线长度：19.5米，宽幅：6.275米，载重：120吨，武器装备：12个回转炮，8个轻炮。
+    Waterline length: 19.5 meters, Beam: 6.275 meters, Deadweight: 120 tons, Armament: 12 swivel guns, 8 light cannons.
 
-10、三等运输舰“登瀛洲”号
+10. **Third-class Transport Ship "Dengyingzhou"**
 
-![三等运输舰“登瀛洲”号]({{ site.img_url }}/a39ab886c9177f3eb0599ce270cf3bc79e3d5646.jpg)
+    ![Third-class Transport Ship "Dengyingzhou"]({{ site.img_url }}/a39ab886c9177f3eb0599ce270cf3bc79e3d5646.jpg)
 
-书中原型：临高拖风，船长22米，排水量78吨。增装二台12千瓦常柴动力的单缸柴油发动机。
+    In-book prototype: Lingao Tuofeng, a type of junk, with a length of 22 meters and a displacement of 78 tons. Additionally fitted with two 12 kW Changchai single-cylinder diesel engines.
 
-附图：北海大拖，总长28.4米，船宽6.90米，型深1.85米，吃水1.5米，排水量184吨，3桅3帆，主桅高20.7米，3帆总面积约385平方米，航行最大风级8级，一般航速6-7节。
+    Appended picture: Beihai Datou, a type of junk, with an overall length of 28.4 meters, a beam of 6.90 meters, a molded depth of 1.85 meters, a draft of 1.5 meters, and a displacement of 184 tons. It has 3 masts and 3 sails, with the main mast being 20.7 meters high. The total sail area is about 385 square meters. It can sail in winds up to force 8, with a general speed of 6-7 knots.
 
-11、“通济”号双桅货船
+11. **"Tongji" Two-masted Cargo Ship**
 
-![“通济”号双桅货船]({{ site.img_url }}/ec0310b30f2442a7da0c9d4ad143ad4bd01302b4.jpg)
+    ![“Tongji” Two-masted Cargo Ship]({{ site.img_url }}/ec0310b30f2442a7da0c9d4ad143ad4bd01302b4.jpg)
 
-400料海南广式海船，船长27米，宽5米多，排水量70吨。
+    A 400-liao Hainan-style sea junk, with a length of 27 meters, a beam of over 5 meters, and a displacement of 70 tons.
 
-12、伏波号双桅快船
+12. **Fubo Two-masted Clipper**
 
-![伏波号双桅快船]({{ site.img_url }}/847674600c3387448e9d4f93510fd9f9d62aa053.jpg)
+    ![Fubo Two-masted Clipper]({{ site.img_url }}/847674600c3387448e9d4f93510fd9f9d62aa053.jpg)
 
-整船全长27.5米，吃水线长21米，两侧舷墙间距6米，排水量100吨。
+    Overall length 27.5 meters, waterline length 21 meters, beam between bulwarks 6 meters, displacement 100 tons.
 
-13、621级500马力蒸汽拖船
+13. **Class 621 500hp Steam Tugboat**
 
-![621级500马力蒸汽拖船]({{ site.img_url }}/a7309a35e5dde71134402319a7efce1b9c166125.jpg)
+    ![Class 621 500hp Steam Tugboat]({{ site.img_url }}/a7309a35e5dde71134402319a7efce1b9c166125.jpg)
 
-附图：哈尔滨船厂1953年制造的“兴山号”蒸汽机明轮拖轮，腰明轮，500马力，长59.36米，宽16.7米，满载吃水1.25米。
+    Appended picture: The "Xingshan" steam-powered side-wheeler tugboat, built by the Harbin Shipyard in 1953. Side-wheeler, 500 horsepower, length 59.36 meters, beam 16.7 meters, full load draft 1.25 meters.
 
-14、“镇海号”快速风帆炮舰
+14. **"Zhenhai" Fast Sailing Gunboat**
 
-![“镇海号”快速风帆炮舰]({{ site.img_url }}/755a37381f30e9248e4afcde4c086e061f95f7c1.jpg)
+    ![“Zhenhai” Fast Sailing Gunboat]({{ site.img_url }}/755a37381f30e9248e4afcde4c086e061f95f7c1.jpg)
 
-排水量170吨，全长30米，宽7米。吃水3米，连船长只需要9人就可操作，可搭载30人。配备两门24磅短炮（舷炮）和一门12磅长炮（中央回转炮位），如果配备更轻的6磅炮，可安装6-8门。
+    Displacement 170 tons, overall length 30 meters, beam 7 meters, draft 3 meters. Can be operated by a crew of just 9, and can carry 30 people. Equipped with two 24-pounder carronades (broadside) and one 12-pounder long gun (central pivot), or 6-8 lighter 6-pounder guns.
 
-15、“海天号”侦察测绘船
+15. **"Haitian" Reconnaissance and Survey Ship**
 
-![“海天号”侦察测绘船]({{ site.img_url }}/09a615d162d9f2d316f24400a9ec8a136127ccd4.jpg)
+    ![“Haitian” Reconnaissance and Survey Ship]({{ site.img_url }}/09a615d162d9f2d316f24400a9ec8a136127ccd4.jpg)
 
-原“镇海号”炮舰改装，以“美洲号”双桅纵帆船为模板。
+    A refit of the former "Zhenhai" gunboat, modeled after the schooner "America."
 
-16、II级三角帆巡逻艇
+16. **Class II Lateen-rigged Patrol Boat**
 
-![“海天号”侦察测绘船]({{ site.img_url }}/574d8acad1c8a7861cd22ae16709c93d71cf5033.jpg)
+    ![Class II Lateen-rigged Patrol Boat]({{ site.img_url }}/574d8acad1c8a7861cd22ae16709c93d71cf5033.jpg)
 
-排水量为60吨，船上另外设置了3对长橹，用来提供额外的推进力和加速转向。整船采用中岛式布局。前后甲板各设一门12磅1857式滑膛加农炮改装的海军炮。
+    Displacement of 60 tons, additionally equipped with 3 pairs of long oars for extra propulsion and accelerated turning. The whole boat adopts a center-island layout. The fore and aft decks are each equipped with a 12-pounder 1857-style smoothbore cannon modified for naval use.
 
-原型：英国海军17-19世纪的“海盗追捕船”，重113吨，长65英尺，定员70人，另外配有七付船桨。装备12门9磅炮。
+    Prototype: The British Navy's "pirate chaser" from the 17th-19th centuries, weighing 113 tons, 65 feet long, with a crew of 70, and also equipped with seven pairs of oars. Armed with 12 9-pounder cannons.
 
-17、901级四级炮舰
+17. **Class 901 Fourth-rate Gunboat**
 
-![901级四级炮舰]({{ site.img_url }}/cb6a84504fc2d562251cb302e71190ef77c66c9f.jpg)
+    ![Class 901 Fourth-rate Gunboat]({{ site.img_url }}/cb6a84504fc2d562251cb302e71190ef77c66c9f.jpg)
 
-原型：美国南北战争时期北方的“90-day gunboat”， 附图为首舰USS Unadilla号。
-水线舰长48米，宽8.5米，最大吃水2.9米，排水量690吨，载重507吨，双桅Barquentine帆装。安装一台500马力蒸汽机，单螺旋桨。另安装12马力辅助蒸汽机1台。最大速度10节。船员114人。海军部将其定为四级炮舰。定位是更多的担负航线护航和远程巡逻任务。
+    Prototype: The Union's "90-day gunboat" from the American Civil War. The appended picture is of the lead ship, the USS Unadilla.
+    Waterline length 48 meters, beam 8.5 meters, maximum draft 2.9 meters, displacement 690 tons, deadweight 507 tons, two-masted Barquentine rig. Equipped with one 500-horsepower steam engine, single screw propeller. Also equipped with one 12-horsepower auxiliary steam engine. Maximum speed 10 knots. Crew of 114. The Admiralty has designated it as a fourth-rate gunboat. Its role is to undertake more convoy escort and long-range patrol missions.
 
-18、1630级铁肋木壳飞剪首蒸汽辅助动力风帆巡洋舰
+18. **Class 1630 Iron-ribbed, Wood-hulled, Clipper-bowed, Steam-assisted Sailing Cruiser**
 
-![1630级铁肋木壳飞剪首蒸汽辅助动力风帆巡洋舰]({{ site.img_url }}/f516f4f81a4c510fbea681f56059252dd52aa555.jpg)
+    ![Class 1630 Iron-ribbed, Wood-hulled, Clipper-bowed, Steam-assisted Sailing Cruiser]({{ site.img_url }}/f516f4f81a4c510fbea681f56059252dd52aa555.jpg)
 
-（附图：清末福建船政局制造的第一艘近代化军舰“万年清号”）
+    (Appended picture: The "Wannianqing," the first modernized warship built by the Fuzhou Arsenal in the late Qing Dynasty)
 
-以1860年代的蒸汽－风帆合动力巡洋舰为蓝本的。排水量1160吨，长70米，宽9.9米，吃水6.25米。安装一台200马力蒸气发动机，航速八节（使用蒸气动力），十六节（风帆动力），载员109人。Barquentine帆装。蒸汽机不仅提供航行动力，也可以提供作风帆的动力。
+    Based on the steam-sail hybrid cruisers of the 1860s. Displacement 1160 tons, length 70 meters, beam 9.9 meters, draft 6.25 meters. Equipped with one 200-horsepower steam engine, speed of eight knots (using steam power), sixteen knots (sail power), crew of 109. Barquentine rig. The steam engine not only provides propulsion but can also power the sails.
