--- a/_posts/2009-9-1-1-00100.md
+++ b/_posts/2009-9-1-1-00100.md
@@ -1,80 +1,80 @@
 ---
 layout: post
-title: 第一节 虫洞降临
+title: "Section 1: The Advent of the Wormhole"
 category: 1
 path: 2009-9-1-1-00100.md
 tag: [normal]
 ---
 
-　　这个故事里的主人公，或者叫主人公之一，叫[萧子山][y001]。
+The protagonist of this story, or rather, one of the protagonists, is named [Xiao Zishan][y001].
 
-　　[萧子山][y001]生在70年代的末期，是个普通人：家庭普通，相貌普通，天资很普通，而且不是个肯努力上进的人，所以读书很一般，受惠于大学的扩招，他也成了一名大学生。
+[Xiao Zishan][y001] was born in the late 1970s and was an ordinary person: ordinary family, ordinary looks, very ordinary talents, and not someone willing to strive for advancement. So, his academic performance was average. Thanks to the expansion of university admissions, he also became a university student.
 
-　　[萧子山][y001]毕业以后，在珠三角的几家企业都呆过，上过黑心老板的当，做过不切实际的梦，最后好歹在一家外企的找了份待遇还不错的工作，勤勤恳恳的干活拿工资——这一干，就是差不多六七年，转眼三十了，住的依然是别人的屋子。平时没什么娱乐，就爱好历史，喜欢看点冷门的书。算是交过个女朋友，破了保留N久的处男之身。不过故事发生的时候，前女友的面容都快记不清了——他照旧属于要庆祝11.11的那伙人。
+After graduating, [Xiao Zishan][y001] worked for several companies in the Pearl River Delta, was deceived by unscrupulous bosses, and had unrealistic dreams. Finally, he found a decent-paying job in a foreign company, working diligently for his salary. He had been doing this for nearly six or seven years. In the blink of an eye, he was thirty, still living in someone else's house. He had few hobbies, just a love for history and reading obscure books. He had a girlfriend once, losing the virginity he had preserved for so long. But by the time our story begins, he could barely remember his ex-girlfriend's face—he still belonged to the group that celebrated Singles' Day on November 11th.
 
-　　我们故事的开头的这天晚上，天气很不好，黑漆漆的天空不断的在闪电——这样的日子持续了快半个月，有时候会在闪电之后下暴雨，有时候则会滚滚雷声，大地震的谣言传了很久,时间久了也慢慢习以为常了。[萧子山][y001]打着哈欠从公交车上下来，眼皮浮肿，两腿酸软，头发蓬乱，一股穷忙族的邋遢派头。他已经一天一夜没回过家了。身为一个新晋的地区经理，为了迎接上级的检查，不得不在办公室里做了很久的报表，特别是那一笔又一笔的报销费用的去向，着实让他伤脑筋。
+On the night our story begins, the weather was very bad. The dark sky was constantly flashing with lightning—this had been going on for almost half a month. Sometimes there would be a downpour after the lightning, other times just rolling thunder. Rumors of a major earthquake had been circulating for a long time, but over time, people had grown accustomed to it. [Xiao Zishan][y001] got off the bus with a yawn, his eyelids swollen, his legs sore, and his hair disheveled, the very picture of a disheveled member of the working poor. He hadn't been home for a day and a night. As a newly promoted regional manager, he had to stay in the office for a long time preparing reports for an inspection by his superiors, especially the whereabouts of one expense reimbursement after another, which really gave him a headache.
 
-　　要说萧某人是个企业里的蛀虫，那是天大的冤枉，[萧子山][y001]正式当上这个职位，还不到三个月。进入这公司的六七年间，一直在地区销售代表这个基本职务上打转，上面的各级领导象韭菜一样割了一茬又一茬，他倒象韭菜根一样的存在着。
+To say that Xiao was a parasite in the company would be a great injustice. [Xiao Zishan][y001] had officially held this position for less than three months. In the six or seven years since he joined the company, he had been stuck in the basic position of a regional sales representative. The various levels of leadership above him had been cut down and replaced like leeks, one after another, while he remained like the root of the leek.
 
-　　三个月前，领导们又一次换班了，照例留下了一堆无法说明的报表和发票。只不过这次，他被指派当了地区经理。
+Three months ago, the leaders had changed shifts again, leaving behind a pile of inexplicable reports and invoices as usual. Only this time, he was appointed as the regional manager.
 
-　　如果早上二年有这个职务……他肯定要对公司感激涕零，但是此时——[萧子山][y001]只想对上面的领导们，无论是从前的还是现在的，说一声：草泥马。
+If he had gotten this position two years earlier... he would have been eternally grateful to the company. But at this moment—[Xiao Zishan][y001] just wanted to say one thing to all the leaders, past and present: Grass Mud Horse.
 
-　　全球经济危机下的公司从去年开始就显得半身不遂，地区办公室里熟悉的同事，也一个接着一个地消失了。剩下的业务，他一个人干还显得悠闲无比。此时这个任命，升职后丝毫也不提调整那多年未动的工资，不给任何的开展业务指示。凭他七八年来的职业经验也不难明白——这是准备撤销地区办公室的前兆。他只不过是一留守人员，等到一切事务处理完毕，就得卷铺盖。
+The company, under the global economic crisis, had been half-paralyzed since last year. Familiar colleagues in the regional office had also disappeared one after another. The remaining business was so little that he felt idle doing it all by himself. This appointment at this time, with no mention of adjusting his long-stagnant salary after the promotion, and no instructions on how to develop the business, made it easy for him to understand with his seven or eight years of professional experience—this was a prelude to the closure of the regional office. He was just a caretaker, and once all matters were settled, he would have to pack up and leave.
 
-　　但是文件还是得做……为了那点多年不动的工资还能多领几个月。
+But the paperwork still had to be done... so that he could receive that long-stagnant salary for a few more months.
 
-　　[萧子山][y001]第二十次的叹气。他提了个大旅行包，从包本身到包里的东西都是办公室里历年留存下来的促销赠品：从厨房围裙、汗衫、牙刷到圆珠笔无所不有。都是些粗劣的小商品。除了少数东西，他基本上都用不到。却还是很贪心的拿了回来——人穷志短——这话放在他身上真是再合适也不过了。
+[Xiao Zishan][y001] sighed for the twentieth time. He was carrying a large travel bag. From the bag itself to its contents, everything was promotional giveaways left over from the office over the years: from kitchen aprons, T-shirts, and toothbrushes to ballpoint pens, there was everything. They were all cheap little commodities. Except for a few things, he basically had no use for them. Yet he still greedily took them back—a man of short will because of poverty—this saying was truly fitting for him.
 
-　　出租房里还算干净整齐，冲个澡之后，精神反而亢奋起来了，随手打开电脑，上了网络。
+The rented room was still clean and tidy. After a shower, he felt invigorated. He casually turned on his computer and went online.
 
-　　奥逊·威尔斯说，彩票是穷人的止痛药，那么网络就是[萧子山][y001]这一类人的鸦片。无论是网游还是BBS，再或者他每天都要看的网络小说。
+Orson Welles said that the lottery is the painkiller of the poor. Then the internet is the opium for people like [Xiao Zishan][y001], whether it be online games, BBS forums, or the web novels he read every day.
 
-　　[萧子山][y001]没工作前也算是半个文艺青年，杂七杂八的书囫囵吞枣地看了不少，也喜欢舞文弄墨，不过天赋有限，没吃上文字饭。上过几年班之后，文艺小说，不管如何的深刻或者有意义，被他彻底的驱逐出去了——社会的一切现实，他看得太多了，不需要再靠小说来给他增加什么感想。他最爱看的，就是各式各样的穿越到过去再造历史的YY小说……这大概和他作为一个历史爱好者，总有一种期望篡改历史的想法有关。总之每天都得看上点，正如他自嘲的说过，这是“精神自慰”。
+Before he started working, [Xiao Zishan][y001] was something of a semi-literary youth. He had read a lot of miscellaneous books without much deep understanding and also liked to write. However, his talent was limited, and he didn't make a living from writing. After working for a few years, literary novels, no matter how profound or meaningful, were completely banished by him—he had seen too much of the reality of society and no longer needed novels to give him any more feelings. What he loved to read most were all kinds of YY novels about transmigrating to the past and remaking history... This was probably related to his being a history lover and always having a desire to tamper with history. In short, he had to read some every day. As he had once said in self-mockery, it was "spiritual masturbation."
 
-　　除了每天的精神自慰，他还固定去几个BBS转转。好像吸毒上瘾的人一样，不去就觉得心里发空，其实坛子里他也不是什么风云人物，但是BBS里提供的各式各样的杂七杂八的信息、理论和知识，各式各样的辩论、争吵，多姿多彩的人性，哪怕是某些上身是马列，下身是西门的伪君子的表演，也比满是面具的社会要有趣的多。
+Besides his daily spiritual masturbation, he also regularly visited a few BBS forums. Like a drug addict, he would feel empty if he didn't go. In fact, he wasn't a prominent figure on the forums, but the various miscellaneous information, theories, and knowledge provided on the BBS, the various debates and quarrels, the colorful display of human nature, even the performances of some hypocrites who were Marxist in their upper body and Casanova in their lower body, were much more interesting than a society full of masks.
 
-　　上BBS，照例先看下本日的热贴。
+On the BBS, as usual, he first looked at the hot posts of the day.
 
-　　“我发现了一个通向明朝的虫洞！千真万确！”
+"I've discovered a wormhole to the Ming Dynasty! It's absolutely true!"
 
-　　看到这题目[萧子山][y001]不由得哑然一笑，这年头，看穿越小说都看傻吗？还是都对自己的现实状况不满，渴望要到另外一个世界去另起炉灶？
+Seeing this title, [Xiao Zishan][y001] couldn't help but smile wryly. Have people gone mad from reading transmigration novels these days? Or are they all dissatisfied with their current reality, eager to start over in another world?
 
-　　再看发现帖子是[文总][y002]发的，说起来[文总][y002]是这个BBS上[萧子山][y001]比较佩服的“生存狂人”之一。知识广博不说，对穿越、生存问题的考量之细腻，也算是少有的。遗憾的是[文总][y002]不写穿越小说，否则他的小说[萧子山][y001]一定是要追看的——当然只看盗版的。
+Then he saw that the post was from [Chief Wen][y002]. Speaking of which, [Chief Wen][y002] was one of the "survivalist maniacs" on this BBS that [Xiao Zishan][y001] admired. Not to mention his broad knowledge, his meticulous consideration of transmigration and survival issues was also rare. It was a pity that [Chief Wen][y002] didn't write transmigration novels, otherwise [Xiao Zishan][y001] would definitely follow his novels—of course, only reading the pirated versions.
 
-　　“又是[文总][y002]的什么新奇思妙想了吧。”[萧子山][y001]随手点了帖子。这一点，他的世界也随之发生了变化。
+"It must be some new whimsical idea of [Chief Wen][y002]'s." [Xiao Zishan][y001] casually clicked on the post. With that click, his world also changed.
 
-　　换成俗套的话，那就是“命运的车轮开始转动”。
+To put it in cliché terms, "the wheels of fate began to turn."
 
-　　一周后。
+**One week later.**
 
-　　“这个就是虫洞？”[萧子山][y001]小心翼翼地看着眼前的发光体。严格的说，这是一个不太正规的圆形，略带蓝色的光，和他想像中的虫洞差距不大，不同之处是光芒并不强，尺寸也小得多，只有盥洗室的一面镜子那么大。
+"This is the wormhole?" [Xiao Zishan][y001] cautiously looked at the luminous object in front of him. Strictly speaking, it was a slightly irregular circle, with a faint blue light. It wasn't much different from the wormholes he had imagined, the only difference being that the light was not strong, and its size was much smaller, only as big as a bathroom mirror.
 
-　　“很小啊。”[王洛宾][y003]说，他和[萧子山][y001]一样，也是第一批和[文总][y002]沟通之后决定来看看的人之一。
+"It's very small," said [Wang Luobin][y003]. Like [Xiao Zishan][y001], he was also one of the first people who decided to come and see after communicating with [Chief Wen][y002].
 
-　　“边缘加以一定的压力就可以扩大。”[文德嗣][y002]坐在抽水马桶的盖子上，卫生间里塞进了三个人显得有些拥挤，“这个洞口可以扩大或缩小，只要在直径方向对称的施以一定的力就行。扩大和缩小洞口在两个时空是同步的。”[文德嗣][y002]解释说，“当把洞口缩小到210mm的时候，虫洞就会封闭，不能连接时空了。”
+"The edge can be expanded with a certain amount of pressure." [Wen Desi][y002] sat on the lid of the toilet. The bathroom was a bit crowded with three people crammed inside. "This opening can be enlarged or shrunk, as long as a certain amount of force is applied symmetrically on the diameter. The expansion and contraction of the opening are synchronized in both spacetimes," [Wen Desi][y002] explained. "When the opening is shrunk to 210mm, the wormhole will close and can no longer connect the spacetimes."
 
-　　“它真得能来回穿越吗？”[萧子山][y001]的印象里，穿越是单向的，基本不是被车撞就是被雷劈，最温柔的也是迷路式的，总得特点就是一去不回。
+"Can it really be traversed back and forth?" In [Xiao Zishan][y001]'s impression, transmigration was one-way. You were either hit by a car or struck by lightning. The gentlest was getting lost. The common feature was that there was no going back.
 
-　　“如果回不来，我发不了帖子，你们也就到不了这里了。”他说，“我估计，穿越过去之后的地点应该是和穿越发生的地方是一致的。”
+"If I couldn't come back, I wouldn't have been able to post, and you wouldn't be here," he said. "I estimate that the location after crossing over should be consistent with the place where the transmigration occurred."
 
-　　“你该去买彩票的，[文总][y002]。”[萧子山][y001]喃喃自语，“在卫生间里发现一个虫洞，比买到头彩的概率还低啊。”
+"You should have bought a lottery ticket, [Chief Wen][y002]," [Xiao Zishan][y001] muttered to himself. "The probability of finding a wormhole in the bathroom is even lower than winning the jackpot."
 
-　　“这个还不算头彩？”[文德嗣][y002]心满意足地笑了起来，“有可以给你赢得一个世界的彩票吗？”
+"Is this not the jackpot?" [Wen Desi][y002] smiled with satisfaction. "Is there a lottery ticket that can win you a world?"
 
-　　“[文总][y002]，你不是一直说：单人双向低调的穿越才是王道。”[王洛宾][y003]想起了当年BBS上关于穿越的讨论。
+"[Chief Wen][y002], didn't you always say: a solo, two-way, low-profile transmigration is the kingly way?" [Wang Luobin][y003] recalled the discussion about transmigration on the BBS back then.
 
-　　“没错。”[文德嗣][y002]指着虫洞，“你知道那后面是什么吗？是一个世界！”他激动的挥舞起了胳膊，“通过它，我可以拥有一个地球、一个宇宙！”
+"That's right." [Wen Desi][y002] pointed at the wormhole. "Do you know what's behind that? A world!" He waved his arms excitedly. "Through it, I can have a planet, a universe!"
 
-　　“就你一个人征服世界？”[萧子山][y001]严重的表示置疑。
+"You alone conquering the world?" [Xiao Zishan][y001] expressed serious doubt.
 
-　　“所以才发了那个帖子……”[文德嗣][y002]好像心有不甘，“另外，对面不是一个令人愉快的时空。”
+"That's why I made that post..." [Wen Desi][y002] seemed a little reluctant. "Besides, the other side is not a pleasant spacetime."
 
-　　“什么时空？”
+"What spacetime?"
 
-　　“大概是天启年间。我找到了天启通宝。”
+"Probably the Tianqi era. I found a Tianqi Tongbao coin."
 
-　　[萧子山][y001]和[王洛宾][y003]都倒吸了一口冷气——[文总][y002]找到的新世界，乃是一个公公横行的时代。
+Both [Xiao Zishan][y001] and [Wang Luobin][y003] gasped—the new world [Chief Wen][y002] had found was an era run rampant by eunuchs.
 
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
