--- a/_posts/2009-9-10-1-01000.md
+++ b/_posts/2009-9-10-1-01000.md
@@ -1,91 +1,92 @@
 ---
 layout: post
-title: 第十节 秘宅
+title: "Section 10: The Secret Residence"
 category: 1
 path: 2009-9-10-1-01000.md
 tag: [normal]
 ---
 
-　　[萧子山][y001]一行忙站起来答应回礼。原先对异时空的人的疑惧心理也少了许多——他们和我们一样，也是活生生的人。特别是高举这几次贸易里的作为让他们觉得这个人颇有信义，值得交往下去，将来穿越之后，必然很大的帮助。
+[Xiao Zishan][y001] and his party hurriedly stood up to return the courtesy. Their initial fear and apprehension towards the people of this other time and space had also diminished considerably—they were living, breathing people, just like them. In particular, Gao Ju's actions in these past few trades made them feel that he was a man of considerable integrity, worthy of continued association, and would surely be of great help after their future transmigration.
 
-　　客套一番之后，进入正题。借助新买的液压手推车的力量，一共拖过来四个仓板、一百多箱的货物。
+After some pleasantries, they got down to business. With the help of the newly purchased hydraulic hand truck, they brought over a total of four pallets and more than a hundred boxes of goods.
 
-　　[萧子山][y001]的促销品已经没有了。本次的交易货物都是去市场上批发来的。采购了许多大小款式不一的镜子、一次性打火机、各种磨砂、喷花的玻璃器皿。[文德嗣][y002]查了很多资料，发现珍珠在明末很值钱，便又去买了许多养殖珍珠，大的小的都有。
+[Xiao Zishan][y001]'s promotional items were all gone. The goods for this transaction were all wholesaled from the market. They had purchased many mirrors of various sizes and styles, disposable lighters, and various kinds of frosted and sandblasted glassware. [Wen Desi][y002] had done a lot of research and found that pearls were very valuable in the late Ming Dynasty, so he went and bought many cultured pearls, both large and small.
 
-　　当下管事领人将货样拆开，一一给高老爷过目，澳洲海商每来必有奇货，这一点高老爷已经有了心理准备，但是每取出一件新东西，心里还是暗自讶异。特别是那一次性的打火机，更是让他爱不释手，此物取火之方便，不是任何火镰火折能比。
+At that moment, the manager led his men to unpack the samples and present them to Master Gao for inspection. Master Gao was already mentally prepared for the fact that the Australian sea merchants would bring strange goods every time they came, but with each new item taken out, he was still secretly surprised. He was especially fond of the disposable lighter, which was far more convenient for making fire than any flint or fire-starter.
 
-　　高老爷端详着手中的温州产打火机——如今半透明的塑料已经引不起他的惊讶了——连打着了几次，凝视半晌赞叹道：“此物的取火法和火镰火石无异，不过以油代火绒，转轮击火。其中并无罕见之物，贵处匠人却能集机巧于一身，做出这样精巧方便的物件来，真是无人能及。”
+Master Gao examined the Wenzhou-made lighter in his hand—the translucent plastic no longer surprised him—and struck it several times. He stared at it for a long while and praised, "The method of making fire with this object is no different from a flint and steel, but it uses oil instead of tinder, and a wheel to strike the flint. There is nothing rare in it, yet the craftsmen of your esteemed country can combine such ingenuity into one body and create such an exquisite and convenient object. It is truly unparalleled."
 
-　　[文德嗣][y002]他们暗暗颔首，谁说古人无知？这个打火机的原理，高老爷入手一看就明白了。当然里面的汽油不是古人能制造的东西，但是他也意识得到里面的液体是油。
+[Wen Desi][y002] and the others nodded secretly. Who said the ancients were ignorant? Master Gao understood the principle of this lighter as soon as he held it. Of course, the gasoline inside was not something the ancients could produce, but he also realized that the liquid inside was oil.
 
-　　“不过这种打火机不能添油，”[文德嗣][y002]解释着，“用完即废了。”
+"But this kind of lighter cannot be refilled with oil," [Wen Desi][y002] explained. "It is useless after it is used up."
 
-　　“这样啊，可惜可惜。”高老爷停下了打火的动作，“为何不能添油？这等精巧实用之物，废了岂不是可惜。”
+"Is that so? What a pity, what a pity." Master Gao stopped flicking the lighter. "Why can't it be refilled? It would be a shame to waste such an exquisite and practical object."
 
-　　[文德嗣][y002]想咋解释一次性商品的概念呢？要告诉他我们来得这个时空的一次性生活，岂不是要把他给吓坏了。便含糊其辞说工匠正在改进中。
+*How do I explain the concept of disposable goods?* [Wen Desi][y002] thought. *If I told him about the disposable lifestyle of the time-space we came from, wouldn't it scare him to death?* So he said vaguely that the craftsmen were working on improvements.
 
-　　交割完货物，一共卖得了三万多两白银，其中几面全身穿衣镜，看得高老爷眼睛都快掉下来了，这玩意就算进到宫里，万岁爷也得瞠目结舌吧。
+After the goods were handed over, they had sold for a total of more than thirty thousand taels of silver. Among them were several full-length dressing mirrors that made Master Gao's eyes nearly pop out. If this thing were to enter the palace, even His Majesty the Emperor would be dumbfounded.
 
-　　带来的珍珠也博得了高举的青睐，自从辽东乱起，东北的贡珠已经断了，南海珠收获也不多，市场上缺货缺得厉害。
+The pearls they brought also won Gao Ju's favor. Since the chaos in Liaodong, the supply of tribute pearls from the northeast had been cut off, and the harvest of South Sea pearls was not large. The market was severely short of stock.
 
-　　高老爷知道他们喜欢金子，兑了一千两黄金，又命人把库里的瓷器拿出来，仓板上能放多少放多少，都用草绳捆紧了。实话说他不知道这三个人是怎么一次比一次多的运送货物的，虽然不敢问，却猜想这几个人是不是会什么搬运术之类的法术。
+Master Gao knew they liked gold, so he exchanged one thousand taels of gold for them. He also ordered people to take out the porcelain from the warehouse, put as much as could fit on the pallets, and tie them tightly with straw ropes. To be honest, he didn't know how these three people managed to transport more and more goods each time. Although he didn't dare to ask, he guessed that these people might know some kind of transportation magic.
 
-　　[萧子山][y001]见厅里那一箱箱的黄金白银，真有点眩晕的感觉。幸好买了液压拖车，要不这快一吨的金银可怎么搬那……正胡思乱想着，却听[文德嗣][y002]问起委托买房之事。
+[Xiao Zishan][y001], seeing the chests of gold and silver in the hall, felt a little dizzy. Fortunately, they had bought the hydraulic cart, otherwise how would they move nearly a ton of gold and silver... As he was lost in thought, he heard [Wen Desi][y002] ask about the matter of entrusting him to buy a house.
 
-　　高举沉吟片刻，说：“此事原没什么难办的。只是几位倌人都是海外商贾，按我大明律法是不能在本地买房居住的。本来诸位都是华夏苗裔，言语相貌也类中华，换了衣冠要是悄悄的住下也不难。只是最近这些奇货上市，我这里颇受人关注……”
+Gao Ju pondered for a moment and said, "This matter was originally not difficult. However, you gentlemen are all overseas merchants. According to the laws of our Great Ming, you cannot buy a house and reside here locally. Originally, you are all of Chinese descent, and your speech and appearance are also like Chinese. If you changed your clothes and lived here quietly, it would not be difficult. But recently, with these strange goods on the market, my place has attracted a lot of attention..."
 
-　　说到这里，他们明白这是树大招风了。想来这广州城里突然冒出来这许多前所未见的东西，不知道有多少耳目眼睛注意着这里。
+At this point, they understood that the tall tree attracts the wind. They figured that with so many unprecedented things suddenly appearing in Guangzhou, there must be countless eyes and ears paying attention to this place.
 
-　　只是这样原打算在广州城内安下据点的计划就落空了，根据穿越总体战略计划中的关键一环：广州将作为根据地的大陆贸易门户，输出海南根据地制造的现代工业产品，输入各类物资、人员。同时也是观察明朝动向的一个窗口。
+But this meant that their original plan to set up a base in Guangzhou city had fallen through. According to a key part of the overall transmigration strategic plan, Guangzhou would serve as the mainland trade portal for the base, exporting modern industrial products manufactured in the Hainan base and importing various materials and personnel. At the same time, it would also be a window for observing the movements of the Ming Dynasty.
 
-　　眼见[文德嗣][y002]一行面露失望之色，高举这才把自己的方案说出来。这个方案他考虑过许久。在高老爷想来，澳洲海商之所以要买房，无非是因为他们要长期来往贸易，需要有个稳定的落脚点存货住人，这和佛郎机人当初贿赂大吏，租得濠镜澳的用意是一样的，只不过他们没那么大的胃口而已。
+Seeing the disappointed look on the faces of [Wen Desi][y002] and his party, Gao Ju then revealed his own plan. He had considered this plan for a long time. In Master Gao's mind, the reason the Australian sea merchants wanted to buy a house was nothing more than that they needed a stable foothold to store goods and live in for their long-term trade. This was the same intention as when the Franks bribed high officials to lease Macau, only they were not so greedy.
 
-　　“不过，敝人倒是另有一个主意……”高举拈着几根稀疏的胡子，探寻地望着一众人。
+"However, I have another idea..." Gao Ju stroked his few sparse whiskers and looked at the group expectantly.
 
-　　“请高老爷明示。”
+"Please enlighten us, Master Gao."
 
-　　“贵客们所想，无非是要在城内有个落脚之处。敝人在城里有个下处，如贵客不嫌弃，可以一用。”
+"What you esteemed guests want is nothing more than a place to stay in the city. I have a place in the city. If you esteemed guests do not mind, you can use it."
 
-　　当下高举斥退丫鬟，传来二名贴身家丁随身，自袖了钥匙在前引路。一行人穿过夹弄，直到后院，空气中有股骡马的尿骚味，便知已到了骡马院，见高老爷并不进去，直接绕过墙角，夹道底是间小小的房子。门口坐着个老仆，见老爷到来，忙站起身来。
+At that, Gao Ju dismissed the maids, summoned two personal servants to accompany him, and led the way with the keys from his sleeve. The group passed through a side alley and reached the backyard. There was a smell of mule and horse urine in the air, so they knew they had reached the mule and horse yard. Seeing that Master Gao did not go in, but went directly around the corner of the wall, at the end of the alley was a small house. An old servant was sitting at the door. Seeing the master arrive, he hurriedly stood up.
 
-　　“把门打开。”高举吩咐。
+"Open the door," Gao Ju ordered.
 
-　　老仆从衣下掏出一管钥匙，引他们进屋。里屋里的墙壁上又开了一扇包铁皮的小门。落锁去闩出去一看，已经是在宅第之外了。这是一条极为僻静的石子小路，沿着城墙根延伸，一面是墙基下的废地，一面则是大户人家后院的高墙，四下无人，路畔杂草丛生。一路走过去，间或可以看到岔巷。
+The old servant took out a key from under his clothes and led them into the house. On the wall of the inner room was another small, iron-clad door. After unlocking and unlatching it, they went out and found themselves outside the residence. This was an extremely secluded stone-paved path that extended along the base of the city wall. On one side was the wasteland at the foot of the wall, and on the other was the high wall of a large household's backyard. There was no one around, and weeds grew along the path. As they walked along, they could occasionally see side alleys.
 
-　　“巷子是通向前门大路的，巷口都设木栅门。平时都锁闭着。这路虽是公地，一般人却是进不来的。”
+"The alleys lead to the main road in front. The entrances to the alleys are all equipped with wooden gates, which are usually locked. Although this road is public land, ordinary people cannot enter."
 
-　　走过了好几百米，走到一面风雨侵蚀剥落得极其破烂的后墙边，开锁进得门去，却是一个小小的青石板后院。种着些芭蕉花草，很是幽静。再往里走是三进小院落，收拾的极干净，家具用品一应俱全。
+After walking for several hundred meters, they came to a back wall that was extremely dilapidated from the erosion of wind and rain. Unlocking the door and entering, they found a small, bluestone-paved backyard. Some banana trees and flowers were planted, making it very quiet. Going further in was a small courtyard with three sections, tidied up very cleanly, and fully furnished with furniture and daily necessities.
 
-　　“这是敝人的外宅。原是备而不用的。”
+"This is my outer residence. It was originally kept in reserve and not used."
 
-　　原来这是高老爷的秘宅。这样的宅子，他在广州城里外还有多所。这座则是用来万一发生什么灾祸可供一时躲避的。
+It turned out that this was Master Gao's secret residence. He had several such residences in and around Guangzhou. This one was for temporary shelter in case of any disaster.
 
-　　宅子的前门并不临街，临街的是一座杂货铺，表面上看，这是家普普通通的油盐店，做些这街上大户人家的买卖，实际上却是高老爷安排的。铺子旁侧有扇不起眼的小门，有夹弄直接连到宅子，出入方便。
+The front door of the residence did not face the street. Facing the street was a grocery store. On the surface, it was an ordinary oil and salt shop that did business with the large households on this street, but it was actually arranged by Master Gao. Next to the shop was an inconspicuous small door, with a side alley directly connected to the residence, making it convenient to enter and exit.
 
-　　宅中也有仆人照看，见老爷带人来了，忙烧水送茶。
+The residence was also looked after by servants. Seeing the master bring people, they hurriedly boiled water and served tea.
 
-　　“我们通洋贩海之人，不得不十分慎重！”高老爷慨叹道，“营生不易。”
+"We who trade on the seas must be very cautious!" Master Gao sighed. "Making a living is not easy."
 
-　　做走私买卖，交往的都非善类，各路水匪海盗，山寇强人都是见财起意的人物，劫人勒索，杀人越货的事情，在这行里不算新闻。
+In the smuggling business, the people one deals with are not good people. All kinds of river bandits, sea pirates, mountain bandits, and strongmen are people who are moved by the sight of wealth. Robbery, extortion, murder, and robbery are not news in this line of work.
 
-　　他们虽然在府、省和两京里都各有靠山，但是官吏横暴，常会有需求勒索。而且朝廷对通洋之事本身就心存疑虑，时有禁止佛朗机人来广州贸易的朝议。地方大吏每每以此要挟商户，以图报晓。
+Although they had backers in the prefecture, province, and the two capitals, the officials were tyrannical and often demanded extortion. Moreover, the court itself was suspicious of foreign trade, and there were often court discussions about prohibiting the Franks from trading in Guangzhou. Local high officials often used this to threaten the merchants in order to report their achievements.
 
-　　“这些多少还好应付！唯最近海贼遍起，番船洋船受害甚众，我等生计也艰难起来。”
+"These are somewhat manageable! But recently, pirates have risen everywhere, and both foreign and Chinese ships have suffered greatly. Our livelihood has also become difficult."
 
-　　[萧子山][y001]想这倒是打听目前粤闽沿海海盗状况的好机会，便故意说：
+[Xiao Zishan][y001] thought this was a good opportunity to inquire about the current situation of pirates on the coast of Guangdong and Fujian, so he deliberately said:
 
-　　“我等自澳洲一路行船，路上倒还安静。”
+"We have sailed all the way from Australia, and the journey has been quiet."
 
-　　“这是贵客们吉人自有天相。”高老爷苦笑，“不过比起闽浙来这边还算太平，海澄如今都给糟践完了。”
+"It is because you esteemed guests have heaven's blessing," Master Gao smiled bitterly. "But compared to Fujian and Zhejiang, it is still peaceful here. Haicheng has been completely ravaged now."
 
-　　天启二年以来，闽广沿海一带海寇招徒结党，称王称国，其中以杨六、蔡三、钟六等最强。天启六年福建总兵俞咨皋和广东水师会剿，招抚了杨六，蔡三、钟六外逃，算是稍稍遏制了海寇的气焰。
+Since the second year of the Tianqi reign, sea pirates along the coast of Fujian and Guangdong had recruited followers and formed gangs, calling themselves kings and states. Among them, Yang Liu, Cai San, and Zhong Liu were the strongest. In the sixth year of Tianqi, the Fujian General-in-Chief Yu Zigao and the Guangdong navy launched a joint suppression campaign, pacifying Yang Liu. Cai San and Zhong Liu fled, which somewhat curbed the arrogance of the sea pirates.
 
-　　然而没多久，郑芝龙、钟凌秀、李魁奇等股海寇又寇掠闽浙沿海，福建沿海受其荼毒最深，隆庆开市以来中国最大的出口贸易港海澄县的月港残破不堪。从那里出洋的海船畏惧海寇掳掠，已经少了许多。
+However, not long after, pirate groups such as Zheng Zhilong, Zhong Lingxiu, and Li Kuiqi once again plundered the coasts of Fujian and Zhejiang. The coast of Fujian suffered the most from their poison. Yuegang in Haicheng County, the largest export trade port in China since the opening of the market in the Longqing reign, was in ruins. The number of sea ships sailing from there had decreased significantly for fear of being plundered by the sea pirates.
 
-　　“广州这里，福建的俞督帅和本省水师去年会剿之后还算安静。佛郎机人因为濠镜澳利益所在，也在江口巡航。”
+"Here in Guangzhou, it has been quiet since the joint suppression by Governor Yu of Fujian and the provincial navy last year. The Franks, because of their interests in Macau, also patrol the mouth of the river."
 
-　　这么说来，这个时期，海盗的活动重点是在福建沿海。这个情况大大增强了他们的信心——起码他们在一开始不会面对郑芝龙、李魁奇这类BOSS级人物了。
+So, during this period, the focus of pirate activity was on the coast of Fujian. This situation greatly boosted their confidence—at least they would not have to face BOSS-level figures like Zheng Zhilong and Li Kuiqi at the beginning.
 
-　　“不过，还是小心为上。”高举说着提醒他们，广东沿海这边虽然没什么巨寇，但是小股海盗水匪多如牛毛。他们远道而来人地生疏，泊船上下尤其要小心。
+"However, it is still best to be careful," Gao Ju said, reminding them. Although there were no major pirates on the coast of Guangdong, small groups of sea pirates and river bandits were as numerous as ox hair. They had come from afar and were unfamiliar with the place and people, so they had to be especially careful when docking and unloading their ships.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
