--- a/_posts/2009-9-11-1-01100.md
+++ b/_posts/2009-9-11-1-01100.md
@@ -1,76 +1,77 @@
 ---
 layout: post
-title: 第十一节 奴仆（一）
+title: "Section 11: Servants (Part 1)"
 category: 1
 path: 2009-9-11-1-01100.md
 tag: [normal]
 ---
 
-　　“我等省得，多谢高老爷。”[文德嗣][y002]只是称谢，并不言及其他。
+"We understand, thank you, Master Gao." [Wen Desi][y002] merely expressed his thanks and said nothing else.
 
-　　高举见他们对自己的船不肯多言，也不便问。只叫传来了看守宅子的仆人来见：一对中年夫妻领着一双十三四岁的少年男女，都过来磕头请安。
+Gao Ju saw that they were unwilling to say much about their ship, so he didn't press the matter. He just called for the servants who looked after the house to come and meet them: a middle-aged couple leading a pair of thirteen or fourteen-year-old boy and girl. They all came over to kowtow and pay their respects.
 
-　　“这一房家人，虽不是家生子，却是敝人从多年前从江西捡回命的人，都是忠诚可靠之辈。”
+"This family of servants, although not born in the house, are people whose lives I saved from Jiangxi many years ago. They are all loyal and reliable."
 
-　　闻听主人如此说话，一家人又连连磕头。
+Hearing the master speak thus, the family kowtowed again and again.
 
-　　“免了免了。”高举吩咐道，“这几位老爷，以后便是尔等的主人了，要尽心服侍。”
+"That's enough, that's enough." Gao Ju instructed, "These gentlemen will be your masters from now on. You must serve them with all your heart."
 
-　　“是，小的们知道！”说着，这一家人都过来给[文德嗣][y002]一行人磕头，“小的们见过老爷。”
+"Yes, we servants know!" With that, the whole family came over to kowtow to [Wen Desi][y002] and his party. "We servants greet our masters."
 
-　　“这这这……”三个人吃了一惊，欠起身来。他们都是现代人，忽然这一大家人都跪在地上给你磕头，任谁都要不适应起来。
+"This, this, this..." The three men were taken aback and half rose from their seats. They were all modern people. To suddenly have a whole family kneeling on the ground and kowtowing to you, anyone would feel uncomfortable.
 
-　　“这是他们的身契。”高老爷从袖中取出几张纸，“都是卖绝了的，贵客们尽可驱使，毋须多虑。”
+"These are their deeds of sale." Master Gao took out a few sheets of paper from his sleeve. "They are all sold absolutely. You esteemed guests can command them as you wish, without any worries."
 
-　　“这是本处宅子的房契。”高老爷又拿出一张文书来，“原说代贵客们买房的，一时不方便。此处陋宅若不嫌弃，就请暂居。”
+"This is the deed to this residence." Master Gao took out another document. "I had originally said I would buy a house on your behalf, but it was inconvenient for a time. If you do not dislike this humble abode, please take up temporary residence here."
 
-　　“这个……”三人面面相觑。这商人好大的手面！虽然他这赠房送仆笼络之意极明显，但是出手如此豪爽，足见诚意。
+"This..." The three men looked at each other. This merchant had a grand style! Although his intention of currying favor by gifting a house and servants was extremely obvious, his出手 was so generous that it showed his sincerity.
 
-　　然而仔细想来，这个天上掉下来的馅饼别有内涵。
+However, upon careful consideration, this pie falling from the sky had another meaning.
 
-　　宅子是他的私宅，一应底细他都知道，要是想暗中探访监视，他在暗，穿越者在明。
+The house was his private residence. He knew all its details. If he wanted to secretly investigate and monitor them, he would be in the dark, and the transmigrators in the light.
 
-　　这家家人是其蓄养多年的，说忠诚可靠，那是对他，可不是对他们这伙来路不明的海商。若是放到他们身边监视的，那穿越者的一举一动一言一行，等于全在他的掌控之中
+This family of servants had been raised by him for many years. To say they were loyal and reliable was to him, not to this group of sea merchants of unknown origin. If they were placed by their side to monitor them, then the transmigrators' every move and every word would be completely under his control.
 
-　　这种感觉，就好像住在玻璃房子里，还一丝不挂。
+This feeling was like living in a glass house, completely naked.
 
-　　高老爷除了笼络他们，重要的是企图把他们控制在手心里。至于为什么这么做，显然是他们带来的货给了高老爷极大的利润。
+Besides currying favor with them, the important thing for Master Gao was to try to control them in the palm of his hand. As for why he did this, it was obviously because the goods they brought had given Master Gao enormous profits.
 
-　　原来只是想买个房子，作为在广州的落脚点，穿越之后再慢慢拓展。现在却白得了一所宅子一房奴仆出来，事情的发展大大的出乎了他们的预料。
+Originally, they had only wanted to buy a house as a foothold in Guangzhou, and then slowly expand after the transmigration. Now, they had gotten a house and a family of servants for free. The development of events had greatly exceeded their expectations.
 
-　　不过，拒绝并非上策。[萧子山][y001]盘算了一下，反正穿越贸易活动也不会再进行几次了。每次只要小心行事，就不会露馅。等穿越之后，这广州城里的活动如何开展，可再做计较。眼下，还是稳住高老爷，让他多多为他们贩货。
+However, refusal was not the best policy. [Xiao Zishan][y001] calculated for a moment. Anyway, the transmigration trade activities would not be carried out many more times. As long as they were careful each time, they would not be exposed. After the transmigration, how to carry out activities in Guangzhou city could be considered again. For now, it was better to stabilize Master Gao and let him sell more goods for them.
 
-　　彼此交换了一下眼色。[文德嗣][y002]便拱手称谢，收了文契。又取出一两银子，算作磕头认主的赏封。
+They exchanged glances. [Wen Desi][y002] then cupped his hands in thanks and accepted the documents. He also took out one tael of silver as a reward for the kowtow acknowledging them as masters.
 
-　　高老爷见他们并无异议，心中甚喜。吩咐家丁把他们的银货都运到新宅里。又命人送了许多食品衣物过来，备极殷勤。
+Master Gao was very pleased to see that they had no objections. He ordered his servants to move all their silver and goods to the new residence. He also ordered people to send over a lot of food and clothing, being extremely attentive.
 
-　　[萧子山][y001]和[文德嗣][y002]、[王洛宾][y003]小声商议一下，觉得既来之则安之。不妨先把这宅子好好的巡查一番，看看如何运用，也顺便摸下奴仆的底。便将男仆叫来问话。
+[Xiao Zishan][y001], [Wen Desi][y002], and [Wang Luobin][y003] discussed in a low voice and felt that since they were here, they should make the best of it. They might as well inspect the house thoroughly first, see how to use it, and also sound out the servants. So they called the male servant over for questioning.
 
-　　男仆看上去颇为老相，[萧子山][y001]估摸着少说也得有五十多了。见他过来侍立伺候，双手下垂，一脸毕恭毕敬之色。[文总][y002]和[王工][y003]都有些不安，[萧子山][y001]却沉住气，先喝了一口茶，沉默半晌，方开始问话。
+The male servant looked quite old. [Xiao Zishan][y001] estimated that he was at least in his fifties. Seeing him come over to stand and wait on them, his hands hanging down, his face full of reverence, [Chief Wen][y002] and [Engineer Wang][y003] both felt a little uneasy. But [Xiao Zishan][y001] remained calm, first taking a sip of tea, and after a long silence, he began to ask questions.
 
-　　这男仆本姓刘名青。原是江西人，佃种着十来亩土地，万历四十五年因本地遭了水灾绝收逃荒。一家人路倒在官道旁待毙之时，正好高老爷南京贩货回来经过，收容了十多家灾民为奴，他也算幸运被选上了，自此就在高家为奴。
+This male servant's original surname was Liu, and his name was Qing. He was originally from Jiangxi and was a tenant farmer of about ten mu of land. In the forty-fifth year of the Wanli reign, he fled the famine after a flood destroyed the crops in his hometown. As his family was on the verge of death by the side of the official road, Master Gao happened to be passing by on his way back from selling goods in Nanjing. He took in more than ten families of disaster victims as slaves, and he was lucky enough to be chosen. From then on, he served as a slave in the Gao family.
 
-　　到了高家之后从了主姓，他也就成高青，老婆便叫高纤，夫妻都在高宅的外院当杂差，不到半个月前才换到这里看守外宅。
+After arriving at the Gao family, he took the master's surname, so he became Gao Qing, and his wife was called Gao Xian. Both husband and wife worked as general servants in the outer courtyard of the Gao residence. It was only less than half a month ago that they were transferred here to guard the outer residence.
 
-　　至于他的年龄，其实不过四十出头。具体几岁，他自己也搞不清。[萧子山][y001]知道旧时农民多有不知道自己确切岁数的，不足为奇。
+As for his age, he was actually only in his early forties. He himself was not clear on his exact age. [Xiao Zishan][y001] knew that it was not uncommon for peasants in the old days not to know their exact age.
 
-　　“在这里看守宅子，比在府里当杂役好吧？”
+"Guarding the house here, is it better than being a general servant in the main residence?"
 
-　　高青苦笑着说：“回老爷的话，这里活少清闲又没人拘束，生计却难了。”
+Gao Qing smiled bitterly and said, "Replying to master, the work here is light and leisurely, and there is no one to restrain us, but making a living has become difficult."
 
-　　原来他和他老婆在府里当差，虽然每人的月钱不过二钱银子，吃饭不花钱，都在公中的大伙房开销，不但自己不饿，一双儿女也能混个肚圆。自换到这里当差，他的月钱是涨到了五钱，但得自己起伙，柴米油盐菜蔬都是自己开销，孩子也混不上饭。十三四的孩子又是能吃的时候，一家人靠七钱银子开销，着实有点吃力。
+It turned out that when he and his wife worked in the main residence, although each person's monthly wage was only two qian of silver, they did not have to pay for food, as it was all provided by the communal kitchen. Not only were they not hungry themselves, but their two children could also get their bellies full. Since being transferred here, his monthly wage had increased to five qian, but he had to cook for himself. Firewood, rice, oil, salt, and vegetables were all his own expenses, and his children could no longer get free meals. Children of thirteen or fourteen are at an age where they eat a lot. The family of four had to live on seven qian of silver, which was really a bit of a struggle.
 
-　　[文德嗣][y002]问：“怎么，孩子没工钱，他们不也是高老爷的吗？”
+[Wen Desi][y002] asked, "What, the children have no wages? Aren't they also Master Gao's?"
 
-　　“孩子们一直没当到差，”高青连连摇头，“不当差，府里不发钱米，都靠老子娘养活。”他又叹了一声，“原想让丫头进到内宅去当差，好歹也能挣一贯钱，丫头长得不好，一直挑不上。托了管家娘子，又非得要十两银子才行。我这一家哪里积攒得下这许多钱！”
+"The children have never been assigned a job," Gao Qing shook his head repeatedly. "If they don't have a job, the residence doesn't give them money or rice. They all rely on their parents to support them." He sighed again, "I originally wanted to get my daughter a job in the inner residence. At least she could earn a string of cash. But my daughter is not good-looking and was never chosen. I asked the housekeeper's wife for help, but she insisted on ten taels of silver. How could my family save up so much money!"
 
-　　这腐败还真是历史悠久，无孔不入啊。在场的三个人都感慨了一下。连当个丫头也得花钱。不过想到《红楼梦》里五儿为了能进大观园的事业单位怡红院当差，柳家的进行的一系列公关活动，这也就不足为奇了。
+This corruption really has a long history and is all-pervasive. The three people present all sighed with emotion. Even to become a maid, one had to spend money. But thinking of the series of public relations activities that Liu's family undertook in "Dream of the Red Chamber" so that Wu'er could get a job in the Yihongyuan, a public institution in the Daguanyuan, this was not surprising.
 
-　　“如今到我们这里当差，你心中可愿意？”[萧子山][y001]放缓了声音问道。
+"Now that you are working for us here, are you willing in your heart?" [Xiao Zishan][y001] asked in a softer voice.
 
-　　高青不安地看了一眼这几个穿衣服都穿得不成模样的海商老爷，应道：“小的们是下人，没什么愿意不愿意的。即是老爷们的人了，但凭老爷们使唤。”
+Gao Qing looked uneasily at these sea merchant masters who couldn't even wear their clothes properly, and replied, "We are servants, there is no such thing as willing or not. Since we are the masters' people, we will do whatever the masters command."
 
-　　[萧子山][y001]点点头，命他带路，先把整座房子都察看了一遍。宅子不大，每进都是一明二暗的格局，一进是客厅书房，二进有楼，是起居之所，三进则设有厨房、柴草房、骡马棚，另有自备水井。房子虽不新，建造的很讲究，都是青砖卧砌，十分坚固。因为是作为紧急状况下避祸之用，房中家具陈设都很简单，倒是生活用品确备得很齐全。厨房里还堆了不少从高宅送了不少大米、咸肉、干鱼并柴米油盐。高青递过礼折请老爷们查点，[文德嗣][y002]本来对这些没什么兴趣，刚想说：“都给你们一家吧。”话没出口，却见[萧子山][y001]拿着折子在那里察看起来了。
+[Xiao Zishan][y001] nodded and ordered him to lead the way, first inspecting the entire house. The house was not large. Each section had a pattern of one bright room and two dark rooms. The first section was the living room and study, the second section had a second floor and was the living quarters, and the third section had a kitchen, a woodshed, a mule and horse shed, and its own well. Although the house was not new, it was very well built, with green bricks laid flat, making it very sturdy. Because it was intended for emergency shelter, the furniture and furnishings in the house were very simple, but the daily necessities were very complete. The kitchen was also piled with a lot of rice, cured meat, dried fish, and firewood, rice, oil, and salt sent from the Gao residence. Gao Qing handed over a gift list for the masters to check. [Wen Desi][y002] was originally not very interested in these things and was about to say, "Give it all to your family." But before the words came out, he saw [Xiao Zishan][y001] taking the list and examining it.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
