--- a/_posts/2009-9-12-1-01200.md
+++ b/_posts/2009-9-12-1-01200.md
@@ -1,126 +1,127 @@
 ---
 layout: post
-title: 第十二节 奴仆（二）
+title: "Section 12: Servants (Part 2)"
 category: 1
 path: 2009-9-12-1-01200.md
 tag: [normal]
 ---
 
-　　查点完毕，回到厅上，高青又把房屋家伙账送上。[萧子山][y001]也不多看，直接收下了事。三个人围着桌子开始画草图。[王洛宾][y003]学过制图，虽然手上只有笔记本和一支圆珠笔，画个建筑平面的草图还是手到擒来。
+After the inspection was complete, they returned to the main hall. Gao Qing presented the household inventory ledger. [Xiao Zishan][y001] didn't look at it much and simply accepted it. The three men gathered around the table and began to draw a rough sketch. [Wang Luobin][y003] had studied drafting, and although he only had a notebook and a ballpoint pen, drawing a rough floor plan of the building was a piece of cake for him.
 
-　　“[子山][y001]，你这人有够抠门，”[王洛宾][y003]边画边说，“还在乎这点咸肉和米的？人家养活一家子不容易，直接给他们不就完了，还能提高忠诚度……”
+"[Zishan][y001], you're quite the cheapskate," [Wang Luobin][y003] said as he drew. "Still concerned about this little bit of cured meat and rice? It's not easy for them to support a family. Just give it to them and be done with it. It would also increase their loyalty..."
 
-　　[萧子山][y001]笑起来：“[王工][y003]，这礼单上光大米就是四十石，按天启末年的米价就是四十两白银。”
+[Xiao Zishan][y001] laughed: "[Engineer Wang][y003], the gift list includes forty shi of rice alone. At the rice prices of the late Tianqi era, that's forty taels of silver."
 
-　　“那又怎么样，难道你想卖了米换白银？”
+"So what? Are you thinking of selling the rice for silver?"
 
-　　“四十两白银，等于高青夫妻四年的工钱。我们现在一出手就是四十两，以后赏多少合适？”
+"Forty taels of silver is equivalent to four years' wages for Gao Qing and his wife. If we give away forty taels right now, how much would be appropriate to reward them with in the future?"
 
-　　“给多了，以后他们的期望值也高了，是这个意思吗？”[文德嗣][y002]说。
+"If we give too much, their expectations will be higher in the future. Is that what you mean?" [Wen Desi][y002] said.
 
-　　“没错，[文总][y002]。”[萧子山][y001]点点头，“高家的确挺艰难，但眼下还过得去。而且他到底是个什么底细我们也不知道，不用急着做好人收买人心。”他压低了声音，“我断定高老爷绝对是对他有所嘱托的，要他注意我们的动静。”
+"Exactly, [Chief Wen][y002]." [Xiao Zishan][y001] nodded. "The Gao family is indeed having a hard time, but they are getting by for now. And we don't know his background yet, so there's no need to rush to be a good person and buy his loyalty." He lowered his voice, "I'm certain that Master Gao has definitely instructed him to pay attention to our movements."
 
-　　“对，很有可能。”
+"Yes, that's very likely."
 
-　　“所以我们现在想争取他还有难度。他不了解我们，更怕我们耍什么坏心眼。况且他和我们只不过初次相见，即没功劳也没苦劳，一下赏给那么多东西，他会怎么想？肯定会立马去禀报高老爷。闹半天我们白给了东西，一样不落好。”
+"So it's still difficult for us to try to win him over now. He doesn't understand us, and he's even more afraid that we might have some bad intentions. Besides, he has only just met us. He has no merits and has done no hard work. If we give him so many things at once, what will he think? He will definitely report it to Master Gao immediately. In the end, we will have given away things for nothing and gained no favor."
 
-　　“这话不假。不过要能把他拉过来是最好。”
+"That's true. But it would be best if we could win him over."
 
-　　“恩惠是要给的，但是只能是小恩小惠，逐渐的让他感觉到我们的好处。时间久了，他自然就心向咱们了。而且他不是高老爷的心腹，拉拢起来会容易些。”
+"Favors must be given, but they can only be small favors, gradually letting him feel our benefits. Over time, he will naturally be inclined towards us. And he is not Master Gao's confidant, so it will be easier to win him over."
 
-　　“不是心腹？这宅子是高老爷救命用的地方，看守的人怎么会不是心腹。”
+"Not a confidant? This residence is a place for Master Gao to use in case of emergency. How could the caretaker not be a confidant?"
 
-　　“你没听他说吗？不到半个月前才给拨到这里来的。而且真正的心腹，高老爷不会送给我们。”
+"Didn't you hear him say? He was only assigned here less than half a month ago. And a true confidant, Master Gao would not give to us."
 
-　　“也许是故意说的。他的那些话说不定都是编造的呢？”
+"Maybe he said that on purpose. Maybe everything he said was fabricated?"
 
-　　“这也有可能。但是我观察了一下觉得不像。高青这个人一脸愁苦之色，神情木讷，眼神涣散，不是精明强干之人。”[萧子山][y001]看了一眼外面，“退一步讲，高老爷对我们的态度无外乎是防范和利用，以利用为主。所以也不大可能在监视我们这方面拿出太多的本钱。”
+"That's also possible. But from my observation, I don't think so. Gao Qing has a look of sorrow on his face, his expression is dull, and his eyes are vacant. He is not a shrewd and capable person." [Xiao Zishan][y001] glanced outside. "To take a step back, Master Gao's attitude towards us is nothing more than prevention and utilization, with utilization being the main thing. So it's unlikely that he would invest too much in monitoring us."
 
-　　“那你打算怎么做？”
+"Then what do you plan to do?"
 
-　　“小恩惠还是要给点的，你们看这样安排怎么样……”
+"We still have to give some small favors. What do you think of this arrangement..."
 
-　　正说着话，高家娘子来请示下晚饭怎么安排。[萧子山][y001]看了下手表，发觉已经是下午四点了。
+As they were talking, Mrs. Gao came to ask how to arrange dinner. [Xiao Zishan][y001] looked at his watch and realized it was already four in the afternoon.
 
-　　“晚饭就不用了，叫你们全家都过来。”
+"No need for dinner. Call your whole family over."
 
-　　“其实我倒挺想尝下大明的饭菜是啥滋味。”[王洛宾][y003]一脸神往。
+"Actually, I'd quite like to taste what the food of the Ming Dynasty is like," [Wang Luobin][y003] said with a look of longing.
 
-　　“据说香料味很足……”
+"It's said to be very heavy on spices..."
 
-　　说着话，这一家人都来了。高家娘子模样挺周正，只是又黑又瘦，低头不说话，看起来便是拙于口舌之人。再看一对儿女，男孩子相貌平平，眼神倒还未失去灵动的光彩。虽然做出一本正经的模样，却总在偷偷打量他们。女孩子却和这家人大不一样，皮肤比家人白皙的多，眼睛很大，鼻子小巧挺拔，身材比男孩还高，[萧子山][y001]估计足有一米六以上，心里不禁暗暗疑惑。问道：
+As they were talking, the whole family arrived. Mrs. Gao had regular features, but she was dark and thin, and kept her head down without speaking. She seemed to be a person of few words. Looking at the pair of children, the boy had ordinary features, but his eyes had not yet lost their lively sparkle. Although he put on a serious expression, he was always secretly sizing them up. The girl, however, was very different from the rest of the family. Her skin was much fairer than her family's, her eyes were large, her nose was small and straight, and she was even taller than the boy. [Xiao Zishan][y001] estimated she was over 1.6 meters tall, and couldn't help but feel a secret doubt. He asked:
 
-　　“叫什么名字？”
+"What is your name?"
 
-　　女孩子没想到会先问她话，吃惊地看了一眼[萧子山][y001]，嚅嚅的说不出话来。
+The girl didn't expect to be asked first. She looked at [Xiao Zishan][y001] in surprise and stammered, unable to speak.
 
-　　“老爷问你话呢！”高青喊道，说着又打躬的禀道，“女孩子没见过世面，她没有大名……”
+"The master is asking you a question!" Gao Qing shouted, then bowed and reported, "The girl has not seen the world, she has no formal name..."
 
-　　“让她自己说嘛，你是她老子，替得了她一时，还替得了她一辈子。”
+"Let her speak for herself. You are her father. You can stand in for her for a while, but can you stand in for her for a lifetime?"
 
-　　“奴婢……嗯……叫高大姐……”
+"This servant... um... is called Gao Dajie..."
 
-　　[萧子山][y001]差点没把嘴里的茶喷出来，[王工][y003]和[文总][y002]也都是一幅忍俊不住的样子。高大姐，这名字可真够气派的。这么一说，仔细看这女孩子倒有点杨紫琼细身长腿的样子。
+[Xiao Zishan][y001] almost spat out the tea in his mouth. [Engineer Wang][y003] and [Chief Wen][y002] also looked like they were trying hard not to laugh. Gao Dajie (Gao Big Sister), what a grand name. Now that she said it, looking closely, the girl did have a bit of Michelle Yeoh's slender, long-legged look.
 
-　　高家这几口人都目瞪口呆地看着新主人们，想不出这个名字有什么好笑的。
+The Gao family all stared dumbfounded at their new masters, unable to figure out what was so funny about this name.
 
-　　高青赔笑道：“让老爷们见笑了……乡下女孩子，没正经取过名……”
+Gao Qing said with an apologetic smile, "I have made a fool of myself in front of the masters... a country girl, she was never given a proper name..."
 
-　　“没什么没什么，”[萧子山][y001]哈哈一笑，“即没有名字，就取一个好了。”他的恶趣味冒了出来：“就叫高露洁吧。”
+"It's nothing, it's nothing," [Xiao Zishan][y001] laughed. "Since you don't have a name, let's give you one." His mischievous streak emerged: "Let's call you Gao Lujie (Colgate)."
 
-　　[文德嗣][y002]：“我们的目标？”
+[Wen Desi][y002]: "Our goal?"
 
-　　[王洛宾][y003]：“没有蛀牙！”
+[Wang Luobin][y003]: "No cavities!"
 
-　　三人也顾不得形象，一起狂笑起来。
+The three of them, forgetting their image, burst into wild laughter.
 
-　　高青一家人看到这三个人自从知道了女儿名字之后，一直疯疯癫癫的笑个不停，不由得害怕起来，只在一边赔笑。
+The Gao family, seeing these three men laughing like mad ever since they learned their daughter's name, couldn't help but feel afraid, and could only stand aside and force a smile.
 
-　　[文德嗣][y002]想这丫头按现代人的标准来看是个美人胚子，不过明代人不喜欢这样的女人。可惜身材还是单薄了些，本钱有限，不知道好好调养能不能再改进改进。
+[Wen Desi][y002] thought that this girl was a beauty in the making by modern standards, but people in the Ming Dynasty didn't like this type of woman. It was a pity that her figure was still a bit thin, and her assets were limited. He wondered if she could be improved with good nourishment.
 
-　　“这丫头多大了？”
+"How old is this girl?"
 
-　　“回……回老爷的话，”高青的话都说不利索了，这个[文老爷][y002]眼神飘忽，一个劲的在女儿身上打转，心道不妙，“十……十四了。”
+"Re... replying to master," Gao Qing's words were faltering. This [Master Wen][y002]'s eyes were wandering, circling around his daughter. He had a bad feeling. "Four... fourteen."
 
-　　十四？倒是标准的小萝莉。可惜眼下正事很多，顾不得调教萝莉了。
+Fourteen? A standard little loli. It was a pity that there were many important things to do at the moment, and he had no time to train a loli.
 
-　　[萧子山][y001]小时候练过几天书法，还没忘记繁体字怎么写，就找了张毛边的记账纸，大书：“高露洁”三字，算是起了名。
+[Xiao Zishan][y001] had practiced calligraphy for a few days as a child and had not forgotten how to write traditional characters. He found a piece of rough-edged accounting paper and wrote the three characters "Gao Lujie" in large script, thus giving her a name.
 
-　　“谢老爷赐名。”高青领着女儿磕头道谢。
+"Thank you, master, for bestowing a name." Gao Qing led his daughter to kowtow in thanks.
 
-　　“起来起来，即是主仆，便是一家人了。不必多礼。”[萧子山][y001]说，“你夫妻二人的月钱，还是按旧例。”
+"Get up, get up. Since we are master and servant, we are one family. There is no need for so much ceremony." [Xiao Zishan][y001] said, "Your and your wife's monthly wages will remain the same as before."
 
-　　“谢老爷。”高青放下心来，他原担心新主人会削减月钱。
+"Thank you, master." Gao Qing was relieved. He had been worried that the new masters would reduce their monthly wages.
 
-　　“你家累重，也不容易。这样，每月再给你全家半石米。省下你全家嚼谷开销。”
+"Your family has a heavy burden, and it is not easy. How about this, I will give your whole family half a shi of rice every month. This will save your family's food expenses."
 
-　　“老爷仁厚！”高青感激涕零，差点没跪下。半石米足够全家吃一个月了。这位老爷一句话，等于就涨了他五钱银子。
+"Master is benevolent!" Gao Qing was moved to tears and almost knelt down. Half a shi of rice was enough for the whole family to eat for a month. This master's one sentence was equivalent to raising his wages by five qian of silver.
 
-　　“这是二十两银子。我等出没海波，来往艰难。先预支你们一年的月钱。余下的，算作此处日常的维护开销，至于月米也可以自己去取。”[萧子山][y001]顿了一下，“你可识字？”
+"Here are twenty taels of silver. We travel on the waves of the sea, and our comings and goings are difficult. We will advance you one year's monthly wages first. The rest will be for the daily maintenance expenses of this place. As for the monthly rice, you can go and get it yourself." [Xiao Zishan][y001] paused for a moment. "Can you read?"
 
-　　高青为难的一笑，他儿子却开口道：“小的识字。”
+Gao Qing smiled awkwardly. His son, however, spoke up: "I can read."
 
-　　“哦？”本来[萧子山][y001]也没抱什么希望。
+"Oh?" [Xiao Zishan][y001] hadn't held out much hope.
 
-　　“他打小不当差，总在外账房里厮混，算识得几个字。”高青忙来说明，说着瞪了儿子一眼，小声骂道：“你显摆个什么！”
+"He hasn't had a job since he was little, and he always hangs around in the outer accounting office, so he knows a few characters," Gao Qing hurriedly explained, then glared at his son and muttered in a low voice, "What are you showing off for!"
 
-　　男孩认字不多，在现代只能算个半文盲，不过因为是和账房先生学的，所以还会点记账打算盘，在古代也算难能可贵了。
+The boy didn't know many characters and would only be considered semi-literate in modern times. But because he had learned from an accountant, he also knew some bookkeeping and how to use an abacus, which was quite valuable in ancient times.
 
-　　问了名字，就叫高弟。[萧子山][y001]想，这古代劳动人民的名字还是真是简单明了。
+He asked his name, which was Gao Di. [Xiao Zishan][y001] thought, the names of the working people in ancient times were really simple and clear.
 
-　　“即识字又会记账，日后的这里的账目开销就归你记了。一笔一笔都要记得清楚，明白？每月也给你一钱的月钱。”
+"Since you can read and do bookkeeping, you will be in charge of the accounts here from now on. Every single transaction must be recorded clearly, understand? You will also get a monthly wage of one qian."
 
-　　“小的省得。”高青大喜，领着儿子又连连叩头。
+"I understand." Gao Qing was overjoyed and led his son to kowtow repeatedly.
 
-　　要他记账不在于钱，而是提醒这家人这里的一草一木都是他们的，免得时间久了有鹊占鸠巢的念头——起了这样的念头，做出什么事情都有可能。普通人虽然看起来本分老实，但是在利益面前性情大变的人他见识的太多了。
+Having him keep the accounts was not about the money, but to remind this family that every blade of grass and every piece of wood here belonged to them, to prevent them from getting the idea of the cuckoo occupying the magpie's nest over time—if such an idea arose, anything could happen. Although ordinary people seemed honest and dutiful, he had seen too many people whose temperament changed drastically in the face of profit.
 
-　　穿越者察看地形之后决定把第一进院落里的书房设为穿越点，便吩咐高青，第一进院落每三天打扫一次即可，平时不要入内。
+After inspecting the terrain, the transmigrators decided to set up the crossing point in the study of the first courtyard. They then instructed Gao Qing that the first courtyard only needed to be cleaned every three days, and that he should not enter it at other times.
 
-　　高青虽搞不明白为什么要这么做，但是主人的事情少问为妙这个道理是懂得的。他唯一感到奇怪的，[文老爷][y002]明确的指定了这个了打扫的开始日期。
+Although Gao Qing didn't understand why they had to do this, he understood the principle of asking fewer questions about his master's affairs. The only thing he found strange was that [Master Wen][y002] had explicitly specified the start date for this cleaning schedule.
 
-　　天完全黑了以后，穿越者在新地点打开了虫洞，还好，对面的地点没有发生变动。液压拖车被拉了过来，把几个堆得高高的货板一个一个的拉了过去。
+After it was completely dark, the transmigrators opened the wormhole at the new location. Fortunately, the location on the other side had not changed. The hydraulic cart was brought over, and the several pallets piled high with goods were pulled over one by one.
 
-　　第二天，高青起来的时候，第一进的院子里早已空无一人。他犹豫了一下，出了门，往高宅的后门走去。
+The next day, when Gao Qing got up, the first courtyard was already empty. He hesitated for a moment, then went out and walked towards the back gate of the Gao residence.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
