--- a/_posts/2009-9-14-1-01400.md
+++ b/_posts/2009-9-14-1-01400.md
@@ -1,134 +1,135 @@
 ---
 layout: post
-title: 第十四节 会议——第一次分组
+title: "Section 14: The Meeting - The First Grouping"
 category: 1
 path: 2009-9-14-1-01400.md
 tag: [normal]
 ---
 
-　　[萧子山][y001]从一开始就把目光放在沿海的那些小城市上。经过半个来月的奔波，终于租定了某地的一个县海上民兵训练基地。
+From the very beginning, [Xiao Zishan][y001] had set his sights on the small coastal cities. After half a month of running around, he finally rented a county maritime militia training base in a certain location.
 
-　　穿越公司租用的这个基地，是全民皆兵年代搞的一个训练营地，大裁军之后空了很久，因为地处丘陵地带，除了一个不大的出海训练用小港口，几乎四面环山，交通不便，唯一公路因为无甚价值，保养的很差。
+This base, rented by the Transmigration Company, was a training camp from the era of全民皆兵 (quánmín jiē bīng - every citizen a soldier). It had been empty for a long time after major military downsizing. Because it was located in a hilly area, it was surrounded by mountains on almost all sides, except for a small port for sea training. Transportation was inconvenient, and the only road, having little value, was poorly maintained.
 
-　　这里地处偏僻，闲人很少，容易避人耳目；营房、库房、操场之类的设施虽然破了一点，但是基本齐全，县人武部因为这地方实在地段太差，长期无人问津，索取的租金很低廉，唯一的附加条件是必须继续雇佣二位看门的退休职工，[萧子山][y001]一口答应下来了——他们一人一周轮流住在传达室，除了看看大门，扫扫地也不管其他的事。
+The place was remote, with few idle people, making it easy to avoid public notice. The facilities, such as barracks, warehouses, and a training ground, though a bit dilapidated, were basically complete. The county's People's Armed Forces Department, because the location was so poor and had long been without inquiries, asked for a very low rent. The only additional condition was that they must continue to employ two retired workers as gatekeepers. [Xiao Zishan][y001] readily agreed—they would take turns living in the gatehouse for a week at a time, and besides watching the gate and sweeping the floor, they wouldn't bother with other matters.
 
-　　先找清洁公司把基地里里外外都打扫了一边，又找了装修公司，把破损的玻璃、堵塞的水管什么的都给修补了一下，因为这地方目前还是人武部的后备营房，里面设备都还算齐全，清洁好了再补充一些东西就能直接入住了。
+First, he hired a cleaning company to clean the base inside and out. Then he found a renovation company to repair the broken glass, clogged water pipes, and so on. Because this place was still a reserve barracks for the People's Armed Forces Department, the equipment inside was still quite complete. After cleaning and adding some things, it could be moved into directly.
 
-　　穿越公司，就在某个日子搬迁到了此地，至于广州的办公室，[文德嗣][y002]还是做了保留。毕竟公司的注册地址是在那里。
+The Transmigration Company moved to this place on a certain day. As for the office in Guangzhou, [Wen Desi][y002] still kept it. After all, the company's registered address was there.
 
-　　有了基地之后，第一批骨干人员开始陆续报到。这些都是从报名者当中由[文德嗣][y002]通过长时间接触之后逐一圈定的。基本都是各方面的专才。
+With the base established, the first batch of core personnel began to report for duty one after another. These were all specialists in various fields, hand-picked by [Wen Desi][y002] after long periods of contact from among the applicants.
 
-　　许多人到来的时候满怀疑惑，不少人干脆就觉得这是一个骗局。
+Many people arrived full of doubt, and many simply thought it was a scam.
 
-　　当他们看到成堆的人民币、明代瓷器和那个闪烁着奇异光芒的虫洞之后，他们才意识到这是真得。
+Only when they saw the piles of RMB, the Ming Dynasty porcelain, and the wormhole shimmering with a strange light did they realize it was real.
 
-　　有立刻就逃走了，接受不了——这太疯狂。
+Some fled immediately, unable to accept it—it was too crazy.
 
-　　有的思索了几天，还是走了。
+Some pondered for a few days, but still left.
 
-　　有的则勃发出无法遏止的兴奋，狂热的投入了自己的全部。
+Others burst with irrepressible excitement and threw themselves into it with all their being.
 
-　　有的处变不惊，简单的登记，安顿好就加入了工作。
+Some remained calm in the face of change, simply registered, settled in, and joined the work.
 
-　　一个穿越组织所需要的团队，就这样初步的建立起来。
+The team needed for a transmigration organization was thus preliminarily established.
 
-　　为了便于管理和分工合作，委员会决定召集目前已经报到的人员开了一个全体会议，以便重新建构了穿越组织。
+To facilitate management and division of labor, the committee decided to convene a plenary meeting of all the personnel who had already reported for duty, in order to restructure the transmigration organization.
 
-　　未来穿越之后将采取怎样的政体，这个问题暂时还无法讨论，毕竟参加者还没有到齐，在召开过全体大会来讨论之前不便设立权力机构，所以会议的目的仅限设立一套相当于行政部门的架构。
+What kind of political system to adopt after the future transmigration was a question that could not be discussed for the time being. After all, not all participants had arrived, and it was not convenient to establish a power structure before a general meeting was held to discuss it. Therefore, the purpose of the meeting was limited to establishing a structure equivalent to an administrative department.
 
-　　会议是在基地的大会议室举行的。会议室足够大，足够容纳得下与会的近五十人。桌椅虽然陈旧，倒也还堪用。[萧子山][y001]从柜子里还找到了许多瓷茶杯，连一次性纸杯都免了。唯一增添的东西就是一块白板。
+The meeting was held in the base's large conference room. The conference room was large enough to accommodate the nearly fifty people present. Although the tables and chairs were old, they were still usable. [Xiao Zishan][y001] even found many porcelain teacups in a cabinet, saving them from using disposable paper cups. The only new addition was a whiteboard.
 
-　　[萧子山][y001]拿出了一个录音笔，打开试了试。
+[Xiao Zishan][y001] took out a recording pen and tested it.
 
-　　“我提议人工记录。”有一位年轻的女性站了起来，“听录音整理会议记录很难受，我五笔打字很快，我来好了。”
+"I propose manual recording." A young woman stood up. "It's very difficult to transcribe meeting minutes from a recording. I type very fast with Wubi. I'll do it."
 
-　　“你是？”
+"You are?"
 
-　　最经一下多了好几十陌生面孔，[萧子山][y001]都不认得了，这位女性身材瘦瘦小小的，算不上漂亮，看得出肢体灵活，是个爱好体育的女性。
+With dozens of new faces suddenly appearing, [Xiao Zishan][y001] didn't recognize them all. This woman was thin and small, not particularly beautiful, but it was clear she was physically agile, a woman who loved sports.
 
-　　“我是[李一挝][y006]的女朋友，叫[李元元][y007]。我过去当文秘的，做会议记录小菜一碟。”
+"I am [Li Yiwo][y006]'s girlfriend, my name is [Li Yuanyuan][y007]. I used to be a secretary, so taking meeting minutes is a piece of cake for me."
 
-　　这个[李一挝][y006][萧子山][y001]是知道的，也是学机加工的，一个狂热的枪械爱好者，[展无涯][y004]的枪友，属于半天都没个闷屁的人物。[萧子山][y001]猜他之所以想穿越只不过是为了不受限制的造枪而已。
+[Xiao Zishan][y001] knew of this [Li Yiwo][y006]. He was also in machining, a fanatical firearms enthusiast, a gun buddy of [Zhan Wuya][y004], and the kind of person who wouldn't fart a peep all day. [Xiao Zishan][y001] guessed that the only reason he wanted to transmigrate was to build guns without restriction.
 
-　　这个年轻的女孩子也跟着他来了，“爱你就跟你到天涯海角”看来并不是一句空话。想到这里，[萧子山][y001]不由得酸溜溜的。
+This young girl had also come with him. "I'll follow you to the ends of the earth" was apparently not just an empty phrase. Thinking of this, [Xiao Zishan][y001] couldn't help but feel a twinge of jealousy.
 
-　　“好，不过录音笔也开着好了。”
+"Alright, but let's keep the recording pen on as well."
 
-　　[李元元][y007]提来了一台上网本，随手键入了时间日期，然后转向[萧子山][y001]。
+[Li Yuanyuan][y007] brought over a netbook and casually typed in the time and date, then turned to [Xiao Zishan][y001].
 
-　　“请开始吧。”
+"Please begin."
 
-　　[萧子山][y001]清了清嗓子。
+[Xiao Zishan][y001] cleared his throat.
 
-　　“大家虽然彼此都认得，不过聚在一起还是第一次。我先宣布一下会议规范。
+"Although we all know each other, this is the first time we have gathered together. I will first announce the rules of the meeting.
 
-　　“本次会议按议程逐一讨论各个议题，在未开始讨论新议题前不能离题。
+"This meeting will discuss each topic on the agenda one by one. We cannot deviate from the topic until the discussion of a new topic has begun.
 
-　　“会议可能持续时间较长，对非本专业或者不感兴趣的讨论话题，可离场。离场为每个议题结束之后，新议题未开始之前。或会议主持人宣布的休息时间。
+"The meeting may last for a long time. For discussion topics that are not in your specialty or that you are not interested in, you may leave the room. You may leave after a topic is finished and before a new topic begins, or during the break announced by the meeting moderator.
 
-　　“每个议题结束之后，会议主持人将鸣钟一次，随后等待三分钟再开始新议题。愿意重新入场的，必须在此期间入场。
+"After each topic is finished, the meeting moderator will ring a bell once, and then wait three minutes before starting a new topic. Those who wish to re-enter must do so during this period.
 
-　　“发言举手，征得主持人同意之后才可开始。
+"Raise your hand to speak, and you may only begin after being recognized by the moderator.
 
-　　“发言必须对事，不得涉及对其他发言人的评论。
+"Remarks must be directed at the issue, and must not involve comments on other speakers.
 
-　　“就这么多，”[萧子山][y001]看了看围坐着的穿越众们，笑容可掬的点了下头，“下面我们请[文总][y002]首先介绍下目前的穿越准备活动的进行状况。”
+"That's all." [Xiao Zishan][y001] looked at the transmigrators sitting around him, nodded with a friendly smile, and said, "Now, let's ask [Chief Wen][y002] to first introduce the current progress of the transmigration preparations."
 
-　　[文总][y002]站了起来，咳嗽了一声，一屋子黑压压的人盯着他看。
+[Chief Wen][y002] stood up, coughed, and a room full of people stared at him.
 
-　　“关于目前的穿越状态，我首先来介绍一下。”
+"Regarding the current state of the transmigration, I will first give an introduction."
 
-　　说着[文德嗣][y002]将到目前为止虫洞的现状、穿越贸易情况、与明朝人的接触、获利作了一个简单的介绍。刚介绍完，就有人要求发言。
+With that, [Wen Desi][y002] gave a brief introduction to the current status of the wormhole, the trade situation, the contact with the Ming people, and the profits made. As soon as he finished, someone asked to speak.
 
-　　“我叫[金克绶][y008]。建议[文总][y002]不要再倒卖瓷器了。文物圈子我多少知道一点：都是相当独立又熟悉的，现在出手几件无所谓，如果持续不断的出手的话，没有几天整个省甚至全国的圈子都知道了。这对我们的保密来说是很不利的。到时候恐怕会惊动文保单位。”
+"My name is [Jin Keshou][y008]. I suggest that [Chief Wen][y002] stop selling porcelain. I know a little about the antiques circle: it's quite independent but also very familiar. It doesn't matter if you sell a few pieces now, but if you continue to sell them, the circle in the entire province, and even the whole country, will know in a few days. This is very detrimental to our secrecy. I'm afraid it will alert the cultural relics protection units."
 
-　　[文德嗣][y002]探出身子，很关注，文物圈的事情的确他不大了解：“那你的建议呢？”
+[Wen Desi][y002] leaned forward, very concerned. He really didn't know much about the antiques circle. "Then what is your suggestion?"
 
-　　“药材。”他说，“传统中药材里的许多名贵药现在稀缺得厉害，价格很高。比如犀牛角、天然牛黄、麝香这些。”
+"Medicinal materials," he said. "Many of the precious medicinal materials in traditional Chinese medicine are extremely scarce now, and their prices are very high. For example, rhinoceros horn, natural bezoar, and musk."
 
-　　“犀牛角就算了吧，非把工商局招来不可。”有人提出了异议，“不过名贵香料也可以考虑。”
+"Let's forget about rhinoceros horn. That will definitely attract the Bureau of Industry and Commerce," someone raised an objection. "But precious spices can be considered."
 
-　　“好，这个建议接受了，下次贸易的时候尝试一下。”
+"Alright, this suggestion is accepted. We will try it in the next trade."
 
-　　“下一个议题是工业方面的，首先我们从能源上……”[萧子山][y001]正说着，忽然看到[马千瞩][y005]举手，“什么事？”
+"The next topic is on the industrial side. First, let's start with energy..." [Xiao Zishan][y001] was saying, when he suddenly saw [Ma Qianzhu][y005] raise his hand. "What is it?"
 
-　　“我们是否先把行政架构设立起来，分成不同的专业小组？这样发言起来会比较方便。”
+"Should we first establish the administrative structure and divide into different professional groups? It would be more convenient to speak that way."
 
-　　“嗯，我赞成。”[王洛宾][y003]说，“不然说起来没头绪。”
+"Yes, I agree," said [Wang Luobin][y003]. "Otherwise, it will be disorganized when we talk."
 
-　　“那首先是农业组，”一个健硕的男人站了起来，“我是[吴南海][y009]，XX农大毕业的。民以食为天，吃饭问题是我们的首要任务。”
+"Then first is the Agriculture Group," a sturdy man stood up. "I am [Wu Nanhai][y009], a graduate of XX Agricultural University. Food is the first necessity of the people, and the problem of food is our primary task."
 
-　　“好，农业组。”[萧子山][y001]在白板上写了第一个组。
+"Alright, Agriculture Group." [Xiao Zishan][y001] wrote the first group on the whiteboard.
 
-　　“工业组！”“交通组！”“地质部！”“铁道部！”“公路局”“穿越移动！”“航空委员会！”“军事组！”“陆军部！”“海军部！”“城管局！”“契卡！”“发改委！”
+"Industrial Group!" "Transportation Group!" "Geology Department!" "Ministry of Railways!" "Highway Bureau!" "Transmigration Mobile!" "Aviation Committee!" "Military Group!" "Ministry of the Army!" "Ministry of the Navy!" "Chengguan Bureau!" "Cheka!" "NDRC!"
 
-　　……
+...
 
-　　看到分组开始变成恶搞，[萧子山][y001]只好制止了他们澎湃的激情：
+Seeing that the grouping was starting to turn into a farce, [Xiao Zishan][y001] had to stop their surging passion:
 
-　　“好啦好啦，分组主要是为了进行穿越的准备工作，开基地之后怎么设置机构是另外一回事。大家不要想得太复杂了。”他笑了一下，“咱们还没穿呢，先别搞升官发财那套了吧。”
+"Alright, alright, the main purpose of grouping is for the preparation work of the transmigration. How to set up the organization after we establish the base is another matter. Let's not think too complicatedly." He smiled, "We haven't even transmigrated yet, let's not get into the business of getting promoted and rich just yet."
 
-　　大家都笑了起来，过了一会，分出了以下这些组：
+Everyone laughed. After a while, the following groups were formed:
 
-　　工业、农业、建筑、能源、通讯、体育、IT、情报资料八个专业组。除了专业组，另外设置了总务、采购二个支援组。总务组负责安排协调人员的联络、报到和登记工作以及全体穿越众的日常生活及机构运作；采购负责按采购清单采购各种装备物资。
+Eight professional groups: Industry, Agriculture, Construction, Energy, Communications, Sports, IT, and Intelligence/Data. In addition to the professional groups, two support groups were also established: General Affairs and Procurement. The General Affairs Group was responsible for arranging and coordinating the contact, reporting, and registration of personnel, as well as the daily life of all transmigrators and the operation of the organization; Procurement was responsible for purchasing various equipment and materials according to the procurement list.
 
-　　各小组各自推举出相关的负责人，由各组负责人组成临时执行委员会。每周召开一次协调会议，协调各部门的运作。在需要的时候，也可以临时召开。
+Each group elected its own responsible person, and the leaders of each group formed a temporary executive committee. A coordination meeting was held once a week to coordinate the operations of the various departments. When necessary, it could also be convened temporarily.
 
-　　[文德嗣][y002]毫无意外的成为了执委会主席，本来[展无涯][y004]要推举[王洛宾][y003]做工业组组长，[王洛宾][y003]推辞了，说自己在机械方面不够专业，最后还是[展无涯][y004]做了组长。
+[Wen Desi][y002] became the chairman of the Executive Committee without any surprise. Originally, [Zhan Wuya][y004] wanted to nominate [Wang Luobin][y003] as the leader of the Industrial Group, but [Wang Luobin][y003] declined, saying that he was not professional enough in machinery. In the end, [Zhan Wuya][y004] became the group leader.
 
-　　总务组长无人问津，大伙都不想干。又是管吃喝拉撒，又是管人事，太琐碎。要是一般的企业单位，好歹油水十足。问题他们一年之后就穿了，攒下再多的钞票也都是废纸，最后一样得贡献给组织。
+No one wanted to be the head of the General Affairs Group. No one wanted to do it. It was about managing food, drink, and daily necessities, as well as personnel matters, which was too trivial. If it were an ordinary enterprise, there would at least be plenty of perks. The problem was that they were going to transmigrate in a year, and no matter how much money they saved up, it would all be waste paper. In the end, it would all have to be contributed to the organization.
 
-　　[萧子山][y001]暗示了一下[文德嗣][y002]，然后就由[文德嗣][y002]提名，由他取得了总务组长的位置。
+[Xiao Zishan][y001] hinted at [Wen Desi][y002], and then [Wen Desi][y002] nominated him, and he got the position of head of the General Affairs Group.
 
-　　[萧子山][y001]的想法很简单：自己没有专业技能，准备穿越这个阶段又必然是技术党人大展拳脚发言权上升的时期，用这个位置把自己留在管理层里是最好的。在下一次机构改组的时候，他就有了足够的从政资历了。
+[Xiao Zishan][y001]'s thinking was simple: he had no professional skills, and the preparation stage of the transmigration was bound to be a period when the tech-savvy people would show their talents and their right to speak would rise. Using this position to keep himself in the management layer was the best. In the next institutional reorganization, he would have enough political qualifications.
 
-　　不过，为了尽量避免嫌疑，经[萧子山][y001]提议，在委员会内另外设置委员会直辖会计组，负责经费收入、拨给和审计。
+However, to avoid suspicion as much as possible, at [Xiao Zishan][y001]'s suggestion, a separate accounting group directly under the committee was established within the committee, responsible for revenue, appropriation, and audit.
 
-　　分组完毕，会议室内马上响起了一阵乱哄哄的拉凳子换座位的声音，没人提议，各小组就分组就坐了，新任组长顾盼左右，已经颇有领导的感觉了。
+After the grouping was completed, a chaotic sound of pulling chairs and changing seats immediately filled the conference room. Without anyone suggesting it, the groups sat together. The newly appointed group leaders looked around, already feeling quite like leaders.
 
-　　相形之下，总务组的班底基本上是娘子军，第一批来的都是技术类骨干，所以归在总务组旗帜下的都是这些骨干们带来的女朋友和老婆——还有一位[大妈][y110]，是[某女性技术员][y156]的妈——真是可怜天下父母心……
+In contrast, the core of the General Affairs Group was basically a women's army. The first batch to arrive were all technical core members, so those under the banner of the General Affairs Group were the girlfriends and wives brought by these core members—and also an [auntie][y110], who was the mother of a [certain female technician][y156]—truly, the heart of a parent is pitiful...
 
-　　[萧子山][y001]开始头痛以后怎么和娘子军们相处了。更要命的是，这些还都是“别人的女人”。他暗暗提醒自己要小心避嫌。
+[Xiao Zishan][y001] began to have a headache about how to get along with the women's army in the future. What was worse, these were all "other people's women." He secretly reminded himself to be careful to avoid suspicion.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
