--- a/_posts/2009-9-15-1-01500.md
+++ b/_posts/2009-9-15-1-01500.md
@@ -1,104 +1,105 @@
 ---
 layout: post
-title: 第十五节 会议——能源问题
+title: "Section 15: The Meeting - The Energy Problem"
 category: 1
 path: 2009-9-15-1-01500.md
 tag: [normal]
 ---
 
-　　“那我们先从能源方面谈起吧。”[萧子山][y001]把头转向能源组，“能源是一切的关键。只要我们拥有电力，我们就能够使用从现代机器到电脑等任何工具——这些全面超越古人的优势装备。能源组对我们的电力供应问题怎么看？”
+"Then let's start with energy." [Xiao Zishan][y001] turned his head to the Energy Group. "Energy is the key to everything. As long as we have electricity, we can use any tool from modern machines to computers—these are all superior pieces of equipment that completely surpass the ancients. What is the Energy Group's view on our power supply problem?"
 
-　　能源组里站起来发言的是[常凯申][y010]，作为一个临时工，在某电力集团下属企业已经工作五年，属于干活最多，拿钱最少，功劳没有，黑锅你背的那类的人。
+The person who stood up to speak from the Energy Group was [Chang Kaishen][y010]. As a temporary worker, he had been working in a subsidiary of a certain power group for five years, belonging to the category of people who do the most work, get the least pay, receive no credit, and take all the blame.
 
-　　“根据我们所要面临的状况，采取水电为主，火电、风电为辅的电力策略比较合适。
+"According to the situation we will be facing, it is more appropriate to adopt a power strategy with hydropower as the mainstay, supplemented by thermal power and wind power.
 
-　　“水电的好处很多，这里不多做说明了，对我们这个团队来说最大的好处不需要补充燃料，一次性建设，几乎可以无限期的使用。
+"There are many benefits to hydropower, which I won't elaborate on here. For our team, the biggest benefit is that it doesn't require fuel replenishment. It's a one-time construction and can be used almost indefinitely.
 
-　　“目前农村小水电设备是相当简易的，安装难度低，工程投入也很小。发电使用引水渠，有5－6米水头就可以运转。这类设备技术已经很成熟了，小型和微型的机组国内都实现了系列化标准化制造，维护保养方便，价格也很低。
+"At present, rural small-scale hydropower equipment is quite simple, the installation difficulty is low, and the engineering investment is also very small. It uses an aqueduct for power generation, and can operate with a water head of 5-6 meters. The technology for this type of equipment is already very mature. Small and micro-sized units have been serialized and standardized in China, making maintenance convenient and the price very low.
 
-　　“同时我们还需要火电。火电的原动机可以使用多种方式，柴油发电机使用方便，不需要架设，也不受环境限制，将作为我们登陆早期采取的主要发电手段。”
+"At the same time, we also need thermal power. The prime mover for thermal power can use various methods. Diesel generators are convenient to use, do not require installation, and are not restricted by the environment. They will be the main means of power generation we adopt in the early stages of landing."
 
-　　这时有人举手了：“柴油总有一天要用光的吧，到时候怎么办呢？”
+At this point, someone raised their hand: "The diesel will run out one day, right? What do we do then?"
 
-　　“柴油机比较容易找到替代产品的，我记得用花生油也可以。”能源组有人说了。
+"Diesel engines can be easily modified for alternative products. I remember peanut oil can also be used," someone from the Energy Group said.
 
-　　“呵呵，用不用的了花生油我不知道，但是柴油机可改成煤气机。”[常凯申][y010]想了下，“我在农村的时候看到很多小发电站是使用煤气机的，应该不难。”
+"Hehe, I don't know if peanut oil can be used, but diesel engines can be converted to gas engines." [Chang Kaishen][y010] thought for a moment, "When I was in the countryside, I saw many small power stations using gas engines. It shouldn't be difficult."
 
-　　“我想我们以后能造出柴油的。”[萧子山][y001]说，“继续吧。”
+"I think we will be able to produce diesel in the future," [Xiao Zishan][y001] said. "Please continue."
 
-　　“好的，”他继续说道，“基于不要把所有的蛋放在一个篮子里的态度，中小功率柴油发电机、小水电和小风力发电机都是需要的。另外我们要带一些中等功率水电机组等以后有了足够的工程能力进行机组扩容。至于风力发电机，虽然有功率太小，发电不稳定的问题，但是架设简单，比较适合作为生活区、独立据点和系统的备份电源。”
+"Alright," he continued, "Based on the attitude of not putting all our eggs in one basket, small and medium-power diesel generators, small hydropower, and small wind turbines are all needed. In addition, we need to bring some medium-power hydropower units for future expansion when we have sufficient engineering capabilities. As for wind turbines, although they have the problems of being too low in power and unstable in generation, they are simple to set up and are more suitable as backup power for living areas, independent strongholds, and systems."
 
-　　他笑了一下：“当然电力没这么简单，还涉及到输配电、变压都一系列问题，这个比较专业，我不做说明了。具体的计划还需要相当长的时间才能拿得出。”
+He smiled: "Of course, electricity is not that simple. It also involves a series of issues such as transmission, distribution, and transformation. This is more professional, so I won't explain it. It will take a considerable amount of time to come up with a specific plan."
 
-　　下一个话题依然是能源组回答，即石油类产品的替代。穿越众并不单单需要发电机，他们也需要使用摩托车、汽车和小型的船只。无论汽油还是柴油，都不能长期储存，如果不能燃料自给，这些东西就没有必要带得太多了。
+The next topic was also answered by the Energy Group, namely, the substitution of petroleum products. The transmigrators not only needed generators, but also motorcycles, cars, and small boats. Neither gasoline nor diesel could be stored for a long time. If they could not be self-sufficient in fuel, there was no need to bring too many of these things.
 
-　　“呵呵，会议主持人的话我不敢赞同，”能源组接着站起来发言的是[罗铎][y011]，此人在网络讨论时候就发了大量有关能源方面的长篇累牍的帖子，“不过据说主持人是文科生，可以理解。”
+"Hehe, I dare not agree with the words of the meeting moderator," the next person to stand up and speak from the Energy Group was [Luo Duo][y011]. This person had posted numerous lengthy posts about energy during the online discussions. "But I heard that the moderator is a liberal arts student, which is understandable."
 
-　　[萧子山][y001]的脸一下红了，他最大的怨念就是“文科生”成为一句藐视的评价。他强忍悲愤，故作镇定。
+[Xiao Zishan][y001]'s face turned red. His biggest resentment was that "liberal arts student" had become a contemptuous evaluation. He suppressed his grief and indignation and pretended to be calm.
 
-　　“其实我们要谈的，还是一个原动机问题。”[罗铎][y011]显然没感受到主持人的怨念，“船也好，汽车也好，摩托车也好，都可以使用非石油类的燃料进行驱动，所以石油的代用品问题，并不是我们迫切解决的问题。
+"Actually, what we are going to talk about is still a prime mover problem." [Luo Duo][y011] obviously did not feel the moderator's resentment. "Whether it's a ship, a car, or a motorcycle, they can all be driven by non-petroleum fuels, so the problem of petroleum substitutes is not an urgent problem for us to solve.
 
-　　“基本上，使用石油类燃料的原动机都可以改造成煤气机来驱动，当然这个功率上会受一定的损失。不过二战末期，德国人在装甲输送车和坦克上曾经试验性的安装过煤气发生器，所以功率方面也还能接受。煤气发生器这个技术非常简单实用，实现难度很低。
+"Basically, prime movers that use petroleum-based fuels can be converted to be driven by gas engines. Of course, there will be a certain loss in power. However, at the end of World War II, the Germans experimentally installed gas generators on armored personnel carriers and tanks, so the power is still acceptable. The technology of gas generators is very simple and practical, and the difficulty of implementation is very low.
 
-　　“然后我们不要忘记蒸汽机。汽油机、柴油机才问世多少年？蒸汽机才是工业革命的发动机。”
+"Then we must not forget the steam engine. How many years have gasoline and diesel engines been around? The steam engine is the engine of the Industrial Revolution."
 
-　　“现在有地方买蒸汽机吗？别说打算叫我们造啊。”机械组里有人发话了。
+"Is there any place to buy steam engines now? Don't tell me you plan to have us build them," someone from the Mechanical Group said.
 
-　　“你们搞机械的，做个蒸汽机还不容易？那可是19世纪的产品！”[罗铎][y011]反问，“我们的原动机不可能一直靠储备运转，总有一天要消耗完的。”
+"You guys in machinery, isn't it easy to make a steam engine? That's a 19th-century product!" [Luo Duo][y011] retorted. "Our prime movers can't run on reserves forever. They will be consumed one day."
 
-　　“蒸汽机还真没搞过，”机械组里交头接耳的一小会，[马千瞩][y005]站了起来，“蒸汽机原理大家都明白，现成的设计资料也很多，我们有信心造出来的。锅炉是主要难点，看我们的材料能到什么样的地步，这得看冶金部门的水平了。”
+"We really haven't worked on steam engines before," the Mechanical Group whispered among themselves for a while, then [Ma Qianzhu][y005] stood up. "We all understand the principle of the steam engine, and there are many existing design materials. We are confident that we can build one. The boiler is the main difficulty. It depends on what kind of materials we can get, which depends on the level of the metallurgy department."
 
-　　“目前冶金部门也算在工业组内。”[萧子山][y001]说明了一下，“我记得有这方面的专业人员的。”
+"Currently, the metallurgy department is also considered part of the Industrial Group," [Xiao Zishan][y001] explained. "I remember there are professionals in this field."
 
-　　“不错，我们有个冶金专业的大学生。”说着几个人哈哈大笑了起来，有个年轻的男生不好意思地笑了下。
+"That's right, we have a university student majoring in metallurgy." With that, several people burst into laughter, and a young man smiled embarrassedly.
 
-　　“你们组内先协调出个方案吧。请继续。”
+"Your group should first coordinate a plan. Please continue."
 
-　　“暂时就想到这么多。”[罗铎][y011]显得很兴奋，露出点疲惫的神情来。
+"That's all I can think of for now." [Luo Duo][y011] seemed very excited and showed a hint of fatigue.
 
-　　“为什么不考虑生物柴油？”有人发问了，“最近这方面的报道相当多，很多国家都进入到实用阶段。”
+"Why not consider biodiesel?" someone asked. "There have been quite a few reports on this recently, and many countries have entered the practical stage."
 
-　　“对，我记得海南有一种煤油树，割开树皮流出来的油就能点灯。”
+"Yes, I remember there is a kind of kerosene tree in Hainan. The oil that flows out when you cut the bark can be used to light lamps."
 
-　　“也只能拿来点灯而已，它并不是真正的煤油。”[马千瞩][y005]在那里侃侃而谈，“生物柴油不是一项简单的技术。虽然可用作原料的油料作物有很多种，包括油茶、臭油桐、黄连木、竹桐等等，但产出的油都不能直接做柴油用，必须进行一系列的改性处理，另外，不管你是什么煤油树还是其他什么油料植物，光有几棵或是一小片树林都没用，一般这类种植基地都在百亩以上才能形成有效的供应。”
+"It can only be used to light lamps. It's not real kerosene," [Ma Qianzhu][y005] said eloquently. "Biodiesel is not a simple technology. Although there are many kinds of oil crops that can be used as raw materials, including oil tea, tung oil tree, Chinese pistache, and bamboo tung, the oil produced cannot be directly used as diesel. It must undergo a series of modification treatments. In addition, no matter what kind of kerosene tree or other oil plant you have, just a few trees or a small grove is useless. Generally, this kind of planting base must be over a hundred mu to form an effective supply."
 
-　　“顺便我要指出一点，油楠必须长到胸径到40－50厘米时才能产油。就目前的发现来看，海南只产在三亚、乐东、东方、昌江、白沙这些水温环境较临高、儋州更好的地区。”农业组有人发言了。
+"By the way, I want to point out that the oil nanmu must grow to a diameter at breast height of 40-50 cm to produce oil. According to current findings, in Hainan, it only grows in areas like Sanya, Ledong, Dongfang, and Changjiang, where the water and temperature conditions are better than in Lingao and Danzhou," someone from the Agriculture Group spoke up.
 
-　　“我们可以熬松根油。二战时候日本人这么搞过，不需要什么特殊的设备就能炼出航空汽油来。”
+"We can boil pine root oil. The Japanese did this during World War II. You don't need any special equipment to refine aviation gasoline."
 
-　　“没错，但是这个费效比太可怜了。日本人差不多是全民动员才炼出了区区几万桶，而且海南也没这么多松根给我们挖。”
+"That's right, but the cost-effectiveness is too pitiful. The Japanese mobilized almost the entire population to refine only a few tens of thousands of barrels, and Hainan doesn't have that many pine roots for us to dig up."
 
-　　“酒精呢？”生物燃料党继续着努力。
+"What about alcohol?" the biofuel party continued their efforts.
 
-　　“可以代用，不过酒精的热值太低，而且有发动机积炭的问题，并不是理想的代用品。”
+"It can be used as a substitute, but the calorific value of alcohol is too low, and there is the problem of engine carbon deposits. It is not an ideal substitute."
 
-　　“关于石油类产品的代用问题，我还有一点看法。”又有人站了出来，“我叫钟利时，从事的是油页岩干馏设备设计方面的工作。我曾经为海南的儋州市的一家炼油厂设计过油母页岩的炼油设备。
+"Regarding the issue of substitutes for petroleum products, I have another point of view." Another person stood up. "My name is Zhong Lishi, and I am engaged in the design of oil shale retorting equipment. I once designed oil shale refining equipment for a refinery in Danzhou, Hainan.
 
-　　“该市有丰富的油母页岩储量，油页岩干馏出来的产品可进一步提炼出各种石油产品。这点来看制造汽油和柴油不成问题。”
+"The city has rich oil shale reserves. The products from oil shale retorting can be further refined into various petroleum products. From this point of view, manufacturing gasoline and diesel is not a problem."
 
-　　“儋州在哪里？”下面有人小声的说。
+"Where is Danzhou?" someone below whispered.
 
-　　“就在临高的西面。很近。”
+"It's just to the west of Lingao. Very close."
 
-　　“那这个资源还真是不错。”
+"Then this resource is really not bad."
 
-　　“我简单介绍下，长坡油母页岩含油率5.1%，与褐煤伴生。长坡矿有两层主要矿体。厚度分别为6米、44.5米。开采方式主要为露天开采。
+"Let me briefly introduce it. The Changpo oil shale has an oil content of 5.1% and is associated with lignite. The Changpo mine has two main ore bodies, with thicknesses of 6 meters and 44.5 meters respectively. The main mining method is open-pit mining.
 
-　　“我们可以采取茂名式炉进行处理，处理能力为每炉每日50吨矿石，油回收率60%。结合长坡油母页岩5.1%含油率，每炉每日可出1.5吨原油，这还不包括汽油、氨等副产品。
+"We can use the Maoming-style furnace for processing. The processing capacity is 50 tons of ore per furnace per day, with an oil recovery rate of 60%. Combined with the 5.1% oil content of the Changpo oil shale, each furnace can produce 1.5 tons of crude oil per day, not including by-products such as gasoline and ammonia.
 
-　　“这种炉不需要太多资源和人力就可以建造，投产一座日处理1600吨的小厂，也就是……32座炉，另外还需要瓦斯加热炉2台、通风机房1处、洗涤塔2座、冷却塔2座、烟囱2个——这些我都是现成的设计图纸，设备制造难度也不大。这样的厂一天就能获得原油48吨，还能获得汽油、氨、煤气、酚这些副产品。都是很有用的。
+"This kind of furnace does not require too many resources and manpower to build. To put into production a small plant with a daily processing capacity of 1600 tons, that is... 32 furnaces, plus 2 gas heating furnaces, 1 ventilation fan room, 2 washing towers, 2 cooling towers, and 2 chimneys—I have ready-made design drawings for all of these, and the equipment manufacturing difficulty is not high. Such a plant can obtain 48 tons of crude oil per day, as well as by-products such as gasoline, ammonia, coal gas, and phenol. All are very useful.
 
-　　“油母页岩的原油质量是很好的，可炼制高品质的柴油，所以我认为柴油机和汽油机都可以正常的运作，用不着什么煤气机。”
+"The crude oil from oil shale is of very good quality and can be refined into high-quality diesel. Therefore, I believe that both diesel and gasoline engines can operate normally, without the need for any gas engines."
 
-　　“日处理1600吨！”[罗铎][y011]跳了起来，“我们都去背石头也不够用啊！”
+"1600 tons per day!" [Luo Duo][y011] jumped up. "Even if we all go and carry rocks, it won't be enough!"
 
-　　“对油页岩炼油厂来说，这已经是很小的规模了，”钟利时带着高级知识分子高深莫测的笑容，“现实中是用火车、皮带机运输的，上面油厂的设计产量还不如现实中某页岩油厂的一套装置多。我提供服务的油厂有好几套比这个能力还强的炼油装置，他们一座炉的处理能力是200吨。
+"For an oil shale refinery, this is already a very small scale," Zhong Lishi said with the inscrutable smile of a high-level intellectual. "In reality, trains and belt conveyors are used for transportation. The design output of the oil plant I mentioned is not even as much as one set of equipment in a real-world shale oil plant. The oil plant I provided services to has several sets of refining equipment with even greater capacity than this. The processing capacity of one of their furnaces is 200 tons.
 
-　　“如果觉得长坡的出油率太低的话，山东黄县、蓬莱产的油母页岩品质最好，含油率达到22%。如果我们在一二十年内还不具备石油开采能力的话，可以考虑先把山东拿下来。”
+"If you think the oil yield of Changpo is too low, the oil shale produced in Huang County and Penglai in Shandong is of the best quality, with an oil content of up to 22%. If we still do not have the ability to exploit petroleum in ten or twenty years, we can consider taking over Shandong first."
 
-　　下面的人群又一阵交头接耳。体育组的几个人在翻看中国地图。
+The crowd below started whispering to each other again. Several people from the Sports Group were looking at a map of China.
 
-　　“这个由能源组作为列入远景计划之内吧，看我们的制造业能达到什么样的水平。”[文德嗣][y002]发话了，“我们继续吧。”他看了一下[萧子山][y001]，后者点了点头。
+"Let the Energy Group include this in the long-term plan. We'll see what level our manufacturing industry can reach," [Wen Desi][y002] spoke up. "Let's continue." He looked at [Xiao Zishan][y001], who nodded.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
