--- a/_posts/2009-9-18-1-01800.md
+++ b/_posts/2009-9-18-1-01800.md
@@ -1,118 +1,117 @@
 ---
 layout: post
-title: 第十八节 会议——吃与住
+title: "Section 18: The Meeting - Food and Shelter"
 category: 1
 path: 2009-9-18-1-01800.md
 tag: [normal]
 ---
 
-　　一旦穿越到另一个位面时空，穿越众首先要面临的主要是三个方面的问题：
+Once transmigrated to another plane of existence, the transmigrators would primarily face three main problems:
 
-　　一、基本的生活保障：吃穿不愁。
+1.  Basic life support: no worries about food and clothing.
+2.  Protection from the threat of violence: whether this threat comes from humans or wild animals.
+3.  Protection from the ravages of nature: harsh weather, diseases.
 
-　　二、免受暴力威胁的保障：无论这威胁来自人还是野兽。
+Obviously, compared to the overly professional industrial system issues discussed earlier, most people were more concerned with these personal issues.
 
-　　三、抵御自然界侵害的保障：恶劣的天气、疾病。
+Modern society is a highly developed society with an extremely detailed and specialized division of labor. Every convenience of life that people take for granted—even the simplest and most inconspicuous—requires an entire industrial system to maintain. Before a drop of tap water comes out of the faucet, it is supported by many industries such as electricity, chemical engineering, steel manufacturing, cement, and construction.
 
-　　显然，较之于前面过于专业的工业体系问题，多数人更关心这些切身的问题。
+In 17th-century Hainan, none of this existed.
 
-　　现代社会是一个高度发达，社会分工极度细化、特化的社会，人们习以为常的每一种生活便利——哪怕是最简单，最不起眼的，都需要整整一个工业体系才能维持。一滴自来水在从水龙头里放出来之前，支撑它的有电力、化工、钢铁制造、水泥、建筑等等许多产业。
+Rice existed in the form of unhusked grain. For water, after simple sedimentation, the only method of disinfection was boiling. For clothes, there was no concept of ready-made garments. The rich could hire tailors, while the common people relied on their wives to cut and sew.
 
-　　在17世纪的海南，这一切都没有。
+All daily necessities, even the things we are most accustomed to, things that can be bought cheaply in any small shop, did not exist in that time and space, or rather, existed in a very primitive form.
 
-　　米，是以稻谷的形态存在的。水，简单的沉淀之后，唯一的消毒方法是煮沸。衣服，没有成衣的概念，有钱人可以雇佣裁缝，老百姓就靠自己的老婆裁剪缝补。
+As the head of the Internal Affairs Group responsible for civil affairs, a list of equipment proposed by [Xiao Zishan][y001] sparked a debate.
 
-　　一切生活用品，哪怕我们最习以为常的东西，走进任何一家小店铺都能廉价获得的东西，在那个时空都是不存在的，或者说，以极原生态的方式存在着。
+"Rice milling machines, flour mills, these grain processing equipment, are they necessary to bring? The problem of spare parts, and the power consumption... Ancient times already had water-powered rice milling workshops. For grinding flour, many rural populations in China were still grinding their own wheat in the 1950s."
 
-　　作为负责民生事务的内务组长，[萧子山][y001]提出的一份设备目录引起了争论。
+"Well, I think even if we really want to adopt mechanized production, it can be completely self-made by the mechanical department. Bringing it from this time and space feels like a bit of a waste of tonnage."
 
-　　“碾米机、磨面机，这些粮食加工设备，有必要带吗？备件的问题，还有电力消耗……古代已经有水力的碾米作坊了，磨面，中国老百姓到五十年代还有不少农村人口是自己碾麦子的。”
+"And sewing machines, sergers, cutting tools... Group Leader Xiao, are you planning to open a clothing factory or what?"
 
-　　“嗯，我觉得就算真要采用机械化的生产，也完全可以由机械部门自制，从本时空带过去，有点浪费吨位的感觉。”
+"The Agriculture Group firmly supports the need for grain processing equipment! If the Internal Affairs Group hadn't mentioned it, the Agriculture Group would have requested the purchase of this equipment as well." [Wu Nanhai][y009] stood on his side. "It's about the processing speed! Traditional methods of husking rice and grinding flour are very inefficient. With several hundred of us eating, relying on manual operation would consume too much manpower."
 
-　　“还有缝纫机、拷边机、裁剪工具……萧组长，你准备去开服装厂还是怎么的？”
+"We can use water-powered mills. China had them, Europe had them..."
 
-　　“农业组坚决支持要粮食加工设备！内务组不提的话，农业组也会要求购置这些设备。”[吴南海][y009]站在他这边，“加工速度啊！传统的舂米磨面方式效率非常低下，我们几百号人吃饭，靠手工操作太消耗人力了。”
+"Then we would have to build a special mill. And you're not counting the manpower and material resources consumed? If we have electricity, we can directly drive this equipment and process enough grain very quickly."
 
-　　“可以用水力磨坊啊，中国也有，欧洲也有……”
+"The problem of spare parts for these machines can be solved by the mechanical department." [Xiao Zishan][y001] had anticipated the questions that might be raised about this issue. Now with [Wu Nanhai][y009]'s explanation, it was much easier. "In rural areas, they generally store dry grain. For a transmigration group like ours, the ration is based on the standard of the planned economy era: 12 kilograms of rice per adult per month. If there are 500 people, we need to supply at least 6 tons of rice per month.
 
-　　“那还得专门造一个磨坊。消耗的人力物力就不算了？有电力的话，直接可以驱动这些设备，很快就能加工好足够的粮食了。”
+"This 12-kilogram ration is the standard for ordinary citizens and office workers. The ration for heavy manual laborers needs to be increased. There will be a lot of manual labor after the transmigration, so the consumption will have to be calculated at 14 kilograms. If we also want to bring in local labor, the supply will have to go up another level.
 
-　　“这些机械备件问题，可以由机械部门解决。”[萧子山][y001]对这个问题可能引起的提问做过预想，现在有[吴南海][y009]的解释，就省力多了。“农村一般都是储存干谷的。我们这样一个穿越集团，定量按计划经济时代的标准：成年人每月12公斤大米。如果有500人，每月至少供应6吨大米。
+"The grain processed by machines is of good quality and will not be mixed with impurities. Stone mills have very high requirements for the stone material. If the stone quality is not good, the processed flour will have a lot of grit, which is very bad for everyone's teeth.
 
-　　“这个12公斤定量还是一般市民、职员的标准，重体力劳动者的配给量还要增加。穿越之后会有许多体力劳动，消耗的量就得按14公斤这个数字来计算。如果我们还要引入当地劳动力，供应量还要上一个台阶。
+"As for sewing machines, the principle is the same. Clothes will eventually wear out and need to be replaced. Who do you expect to make the clothes? Your girlfriend? (Laughter)
 
-　　“机器加工出来的粮食质量好，不会掺杂进杂质。石磨对石料有很高的要求，石质不好，加工出来的面粉就会有大量的碎渣，对大家的牙齿很不利。
+"Perhaps you can marry a local woman. She won't know how to make our kind of clothes. It's not difficult to teach her to make clothes, but a purely hand-sewn garment, no matter how skilled, will take several days to make.
 
-　　“至于说缝纫机，道理是一样的。衣服迟早会坏了要更换的，你们指望谁来做衣服？你的女朋友吗？（笑）
+"Of course, you might be able to wait these few days. The problem is that in the future we will need to recruit workers, and even," he lowered his voice, "an army." He raised his voice: "Will the uniforms for these people also rely on your wives sewing them stitch by stitch? (Laughter)"
 
-　　“或许你可以讨个本地的女子，她不会做我们这样的衣服，教她作衣服是不难，但是一件纯手工缝制的衣服，再熟练也得做好几天。
+"According to you, the armies of the ancients didn't wear clothes? Didn't armies of hundreds of thousands also get new uniforms every year?"
 
-　　“当然你或许等得了这几天。问题以后我们要招募工人、甚至，”他压低了声音，“军队。”他提高了声音：“这些人的统一着装也依靠诸位的老婆一针一线的缝出来？（笑）”
+"That was built on the basis of having a large amount of cheap, even free, labor. We don't have that." [Xiao Zishan][y001] looked heartbroken. "Our lives are limited. Our productivity should be more focused on climbing the tech tree. It's better to bring these necessary machines and equipment directly. They can also serve as engineering samples for future replication."
 
-　　“照你这么说古人的军队都不穿衣服了，几十万大军不也每年换装？”
+The housing problem was another issue that everyone was more concerned about. The Internal Affairs Group had originally planned to purchase a large number of tents and establish a tent camp as a transition before formal houses were built. However, the Construction Group's proposal was to purchase prefabricated houses for direct assembly. Such prefabricated houses are common on construction sites—as dormitories and office buildings. The panel materials are diverse and can be selected according to needs. They are lightweight, easy to build, have a certain degree of insulation, and are much more comfortable than tents. Their durability is also good: if properly maintained, they can be used for seven to eight years without any problem.
 
-　　“那是建筑在拥有大量廉价，甚至免费的劳动力的基础上的。我们没有。”[萧子山][y001]做痛心疾首状，“我们的生命是有限得，生产力要更多地放在爬科技树上面。这样一些必须的机器设备还是直接带过去为好。也可以为未来的仿制提供一个工程样品。”
+"A department in our company has been using the simplest color steel prefabricated houses as warehouses and office buildings for almost ten years now, and they are still in very good condition," said [Li Xiaolü][y156], [Auntie Tian][y110]'s daughter, who was a small, slender northern woman, almost thirty, with fair skin and wearing a pair of thin-rimmed glasses. "They can also be made into multi-story buildings, but a light steel structure needs to be added."
 
-　　住房问题是另外一个大家比较关心的问题。内务组原计划采购大批的帐篷，建立一个帐篷营地作为正式建造房屋前的过渡。不过建筑组的提议是采购简易房进行直接组装，这样的简易房屋在工地很常见——作为宿舍和办公用房。板材质地多种多样，可以根据需求选购。重量小，搭建容易，有一定的保温性，较帐篷要舒适的多。耐用性也好：如果维护得当，使用七到八年不成问题。
+"Because the environment we will be facing is relatively harsh," her voice was soft and thin, "we can use higher-grade materials, such as magnesium-phosphate prefabricated houses.
 
-　　“我们公司一个部门，用最简单的彩钢活动房做仓库和办公用房已经快十年了，现在使用状态依然很好。”做介绍的正是[田大妈][y110]的女儿[李潇侣][y156]，是个瘦小的北方女性，差不多三十岁，皮肤白皙，戴着一副细边眼镜，“也可以做成楼房，不过要加轻钢结构。”
+"The walls and roof panels of this type of prefabricated house are made of magnesia composite panels with a polystyrene foam core, with steel doors and windows, and the frame is a light steel keel. Installation does not require special machinery. Four skilled workers using simple tools can assemble a standard house in four hours, which is about 60 square meters.
 
-　　“因为我们要面对的环境比较恶劣，”她的声音又轻又细，“可以采用高档一些的材料，比如磷镁活动房。
+"Its modularity is better than that of color steel houses. It can be arbitrarily added or subtracted in the longitudinal direction, the area can be expanded or reduced at will, and the positions of doors, windows, and front and rear wall panels can be interchanged arbitrarily. After strengthening the structure, it can also be used to build multi-story buildings.
 
-　　“这种活动房的墙体与顶板用的是聚苯乙烯泡沫塑料荚芯的菱镁复合板，钢质门窗，房架为轻钢龙骨。安装不需要特别的机械，熟练工人使用简单工具4个人4小时就能组装一个标准房，大概是60平方米。
+"This kind of house has good sealing, heat insulation, and the housing materials are all fireproof. It is moisture-proof, anti-corrosive, earthquake-resistant, and lightweight. A standard house weighs only 2200 kilograms. The expected service life is more than ten years.
 
-　　“它的组合性比彩钢房要好，在纵向上可以任意加减若干组，面积可以随意扩大或减小，房屋中的门、窗和前后墙板的位置都可以任意互换。在加强结构之后，它也能用来搭建楼房。
+"Dormitories, offices, and small warehouses can all use this type of house."
 
-　　“这种房子的密封性好，隔热保温，房屋材料均为防火材料。耐潮、防腐、抗震、重量轻，一个标准房重量只有2200公斤。预期使用寿命在十年以上。
+"What about for factory buildings?" The Industrial Group was more concerned about this issue.
 
-　　“宿舍、办公室、小型仓库都可以使用这类房子。”
+"It's not suitable for large-span factory buildings and warehouses, but we can use prefabricated houses with washed stone finish." [Li Xiaolü][y156] continued her introduction. "It's actually a simple house with a steel angle structure and cement panels. It's much heavier than ordinary prefabricated houses. The advantage is that its lifespan can reach more than twenty years. It can be used to assemble large-span houses, and can also be used to build 2-3 story buildings."
 
-　　“做厂房呢？”工业组对这个问题比较在意。
+"Cement panels..." someone hesitated.
 
-　　“如果是大跨度的厂房库房是不行的，不过可以用水涮石的简易房。”[李潇侣][y156]继续她的介绍，“实际就是角钢结构的水泥板简易房。它比一般简易房要重得多。好处是寿命可达二十年以上。能组装大跨度的房屋，也可以用来建造2－3层的楼房。”
+"The Construction Group has just discussed it and believes that it is not a big problem for our industrial system to produce cement and angle steel on our own. If the factory building is not particularly urgently needed, we can just bring the drawings and necessary mold tooling materials and build it ourselves with local materials." Her face was a little pale. "However, installing prefabricated houses is a technical job. I suggest that we send some people to this type of prefabricated house company to learn on site."
 
-　　“水泥板啊……”有人在迟疑中。
+[Wen Desi][y002] nodded and made a note in his memorandum: "Practical skills training."
 
-　　“建筑组刚才讨论过，认为我们的工业体系下自产水泥和角钢问题不大。如果厂房不是特别急需的，可只带图纸和必要的模具工装材料，用当地的材料自建。”她的面色有些苍白。“不过安装简易房是一项技术活，我建议要派一些人去这类简易房公司实地学习一下。”
+"Can we install water and electricity in this kind of house?"
 
-　　[文德嗣][y002]点点头，在备忘录上记下了一笔：“实用技能培训”。
+"Yes, although we can't embed pipes in the walls, it's no problem to do surface installation. However, our Construction Group's view is that we should not install separate water supply and drainage systems in dormitories and office buildings to save materials.
 
-　　“住这样的房子能安装水电吗？”
+"For the need for water, we believe it is best to adopt independent public washrooms, including three parts: bathrooms, washrooms, and toilets. This will facilitate the centralized installation of plumbing systems. Considering the rainy problem in Hainan, enclosed corridors will be installed from the dormitories and offices to the public washrooms, so that everyone can use them on rainy days. The temperature in Hainan is not low in winter, so we have not considered a bathroom heating system in the preliminary design."
 
-　　“可以的，虽然不能在墙体内开槽埋管，但是做墙面安装没问题。不过我们建筑组的看法是，宿舍、办公室用房内不安装单独的供排水系统，以节约材料。
+"What about cooling? Hainan is very hot in summer. We need air conditioning."
 
-　　“用水的需求，我们认为最好采取独立公共盥洗房，包括三个部分：浴室、洗脸间和厕所。这样便于集中安装上下水系统。考虑到海南多雨的问题，从宿舍、办公室到公共盥洗室都将安装封闭式的走廊，以便大家在雨天使用。海南冬天温度不低，所以在初步设计里没有考虑浴室供暖这样的系统。”
+Although this person's speech drew a lot of eye-rolls, many people in their hearts were still quite hopeful for air conditioning: they were used to using air conditioning, but in 17th-century Hainan, there wouldn't even be electric fans.
 
-　　“制冷呢？海南夏天可是很热的啊。要有空调。”
+"Traditional air conditioning is definitely impossible." [Li Xiaolü][y156] glanced at [Xiao Zishan][y001]. Seeing that the meeting moderator did not object, she continued, "Traditional air conditioning requires a lot of electricity and chemical refrigerants. It's a bit of a luxury for us. If the Executive Committee ultimately decides to use air conditioning, we have two options available." She seemed a little dizzy, felt nauseous again, and stood for a while holding onto the table before continuing:
 
-　　此人的发言虽然招来了一片白眼。但是许多人的内心其实还是挺巴望有空调的：自己用惯了空调，到了明朝的海南可是连电扇都没有啊。
+"One is a wet-curtain cooling air conditioner, which is actually an evaporative air cooler. It saves the indoor unit fan and compressor, and the refrigerant is water. It is very energy-efficient. The disadvantage is the high humidity, and the manufacturing of this air cooler also has considerable difficulty."
 
-　　“传统的空调肯定不可能了。”[李潇侣][y156]看了一眼[萧子山][y001]，见这位会议主持人没有反对，就谈了下去，“传统空调要大量的电力，还要化学的冷媒。对我们来说是奢侈了一点。要是执委会最终决定要使用空调的话，我们有二个方案可用。”她似乎有点眩晕，又打了一个恶心，扶着桌站了一会，才继续下去：
+"The other is groundwater cooling air conditioning. The principle is similar to radiator heating, but the steam is replaced by groundwater pumped by a water pump. The initial investment for this method is relatively large, requiring deep wells, and the evaporator needs to use copper pipes."
 
-　　“一种是湿帘式冷却空调，实际上就是使用蒸发式换气扇，省掉了内机风扇和压缩机，冷媒是水。用电很节约，缺点是湿度大，而且这个换气扇的制造也有相当的难度。”
+"I personally prefer the second option. Its effect is much better than the first one, and the system is relatively simpler."
 
-　　“一种则是地下水制冷空调，原理类似暖气供暖，只不过蒸汽换成了用水泵抽取的地下水。这种方法的初期投资比较大，要打深井，蒸发器需要用铜管。”
+"Isn't this kind of air conditioning not allowed by the state? They say it wastes water."
 
-　　“我个人比较倾向第二种，它的效果比前一种好的多。系统也相对简单一些。”
+"Damn it, there's no such regulation in the other plane of existence."
 
-　　“这种空调国家是不允许的吧？说浪费水。”
+"Well, I know that. But it still wastes water, it's not environmentally friendly."
 
-　　“靠，另一个位面没这个规定。”
+"Do we still care about environmental protection at that time?"
 
-　　“嗯，这我知道。但是浪费水还是一样的，不环保啊。”
+"The groundwater can be re-injected, so there is no waste," she explained. "If we want something more advanced, we can also use geothermal air conditioning. The method is similar to the second one. At a depth of ten meters underground, the temperature is generally constant at around 20 degrees Celsius. We can achieve warmth in winter and coolness in summer by first drilling to this depth and then circulating water as a heat exchange medium between the underground and the building. In winter, we extract heat from the ground, and in summer, we release heat into the ground. Of course, our camp must be on a geologically stable foundation. If it is too active, it can only provide heat."
 
-　　“那时候还管环保？”
+The eyes of the attendees were all on [Xiao Zishan][y001]—he was in charge of internal affairs. [Xiao Zishan][y001], in turn, looked at [Wen Desi][y002], the chairman. In his heart, he was in favor of any practice that would improve the living conditions of the transmigrators. It is easy to go from frugality to luxury, but difficult to go from luxury to frugality. He understood this basic principle. For a group of mostly pampered city dwellers to start over in a barren land, excessively harsh living conditions would lead to low morale.
 
-　　“可以把地下水回注的，这样就不存在浪费了。”她解释道，“如果要更高级一些，还可以采用地能空调。方式和第二种差不多。地下十米深处一般处于20度左右恒温状态。先通过钻孔达到这一深度，再将水作为热交换媒介在地下和建筑中循环就可以做到冬暖夏凉。冬天从地取热，夏天向地放热。当然，我们的营地得在一个地质结构比较稳定的地基上才行。如果太活跃，就只能供热了。”
+But he did not dare to openly state his position. Such a living system would involve the use of a large amount of industrial resources, and he really did not have the courage to make the decision to approve it.
 
-　　与会者的目光都看着[萧子山][y001]——他是负责内务的，[萧子山][y001]则看着[文德嗣][y002]这位主席。从内心来说，他是赞成一切提高穿越者生活条件的做法的。由俭入奢易，由奢入俭难，这个基本道理他是明白的，一群多半都是养尊处优的城市人，到一个荒芜之地重新开始，生活条件过于艰苦会造成士气低落。
+[Wen Desi][y002] exchanged glances with him for a long time, then looked at the leaders of the various groups for a long time, and finally said a classic line:
 
-　　但是他又不敢公然表态，这样的生活系统要涉及到运用大量的工业资源，他实在没勇气拍这个板说出赞成的意见。
+"Let's study this issue further."
 
-　　[文德嗣][y002]和他目光交流了好一会，又把各个组的组长都看了半天，最后说出了一句经典的台词：
-
-　　“这个问题我们再研究研究吧。”
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y110]: /characters/y110 "曹顺花"
