--- a/_posts/2009-9-19-1-01900.md
+++ b/_posts/2009-9-19-1-01900.md
@@ -1,130 +1,131 @@
 ---
 layout: post
-title: 第十九节 军事问题
+title: "Section 19: Military Matters"
 category: 1
 path: 2009-9-19-1-01900.md
 tag: [normal]
 ---
 
-　　会议持续了差不多一整天，直到天黑才结束。还有许多事务有待解决——具体到细节操作和规划安排——但至少他们已经达成了初步的人员分工，建立起一个粗糙的框架，确定了准备工作的方向。大家也大体知道了要做什么。
+The meeting lasted for almost a whole day, ending only after dark. There were still many matters to be resolved—specifically, the details of operations and planning—but at least they had reached a preliminary division of labor, established a rough framework, and determined the direction of the preparation work. Everyone also had a general idea of what needed to be done.
 
-　　即使这样，一种亢奋的心情弥漫在每个人的心头。委员会明确说明，出了办公楼就不能再谈任何关于穿越的事务，但是实际上沿着荒草丛生的操场跑道散步的三三两两的人群依然在小声的谈论着会议和不同的看法。其中也不乏某些意气相投之辈正在通过谈话增进感情——当然主要是倾诉不满情绪。
+Even so, a sense of excitement filled everyone's heart. The committee had made it clear that no discussion about the transmigration was allowed outside the office building, but in reality, the small groups of people strolling along the weed-strewn running track of the sports field were still talking in low voices about the meeting and their different opinions. Among them, there were also some like-minded people who were strengthening their bonds through conversation—of course, mainly by venting their dissatisfaction.
 
-　　不满的缘由是各式各样的：对某个产业的发展方向，某个设备清单，或许只是对某人的相貌。但是只要有不满便会增进人与人之间的亲密度，这个世界上又没有哪件事情是大家都能满意的。微小的不满，从事业的开端便开始积攒起来了。
+The reasons for dissatisfaction were varied: the development direction of a certain industry, a certain equipment list, or perhaps just someone's appearance. But as long as there was dissatisfaction, it would increase the intimacy between people, and there was no matter in this world that everyone could be satisfied with. Minor dissatisfactions began to accumulate from the very beginning of the enterprise.
 
-　　沉浸在“胜利的大会，团结的大会，成功的大会”的气氛中的执委会自然没有意识到这一点。此时执委会的成员正在单独和体育组的骨干们密谈。
+The Executive Committee, immersed in the atmosphere of a "successful congress, a congress of unity, a congress of victory," was naturally unaware of this. At this moment, the members of the Executive Committee were having a secret talk with the core members of the Sports Group.
 
-　　所谓的体育组，虽然它目前承担着对穿越众的体能锻炼任务，实质却是未来穿越者的暴力机构的雏形，只不过是为了掩人耳目才起了这么一个人畜无害的名字。
+The so-called Sports Group, although it was currently responsible for the physical training of the transmigrators, was in substance the embryonic form of the future violent apparatus of the transmigrators. It was only given such a harmless name to deceive the public.
 
-　　在整个会议中，体育组基本上没有做任何的发言，实际上这也是执委会三头之一的[文德嗣][y002]会前特意和他们打的招呼。体育组的业务范围过于敏感，不宜公开讨论，即使是穿越者的骨干人员。
+Throughout the entire meeting, the Sports Group basically made no statements. In fact, this was a heads-up that [Wen Desi][y002], one of the three heads of the Executive Committee, had given them before the meeting. The scope of the Sports Group's business was too sensitive to be discussed openly, even among the core personnel of the transmigrators.
 
-　　目前的体育组组长，乃是一名销售经理——当然他成为体育组组长并不是因为这个职业——他曾是部队的一名军官，步校的科班出身，在野战部队当过连长，也在机关里干过参谋。是穿越众目前最好的军事班底。
+The current leader of the Sports Group was a sales manager—of course, he did not become the leader of the Sports Group because of this profession. He was a former officer in the army, a graduate of an infantry school, had served as a company commander in a field unit, and had also worked as a staff officer in the headquarters. He was the best military asset the transmigrators currently had.
 
-　　他有一个很牛B的名字，叫席亚洲。
+He had a very awesome name: Xi Yazhou (席亚洲 - Xi Rolls Through Asia).
 
-　　席亚洲和他的体育组同仁，多数是退伍转业军人。人不多，但是从军经历带给他们的军人气质依然可以清晰地感受到。
+Xi Yazhou and his colleagues in the Sports Group were mostly demobilized and transferred military personnel. There were not many of them, but the military bearing brought by their military experience could still be clearly felt.
 
-　　“[文总][y002]，这是北炜，原XX军区侦察大队转业。”
+"[Chief Wen][y002], this is Bei Wei, formerly of the XX Military Region Reconnaissance Brigade."
 
-　　“这是邬德，原海军XX水警区转业。”
+"This is Wu De, formerly of the XX Naval Garrison District."
 
-　　“这是何鸣，”席亚洲带着点崇敬的态度介绍着年龄最长的那位，“曾经作为步兵连长参加两山轮战，在战斗中荣立过……”
+"This is He Ming," Xi Yazhou introduced the oldest one with a hint of reverence, "he once participated in the Two Mountains Border War as an infantry company commander and was decorated for his service in battle..."
 
-　　这个介绍让在场所有人都肃然起敬。这位年近五十的老同志皮肤黝黑，略有花白的寸短发型，腰板笔直的坐着。
+This introduction made everyone present stand in awe. This old comrade, nearly fifty, had dark skin, slightly graying short hair, and sat with his back ramrod straight.
 
-　　听到席亚洲的介绍，何鸣挥了下手：“小席，说这些做什么！军人打仗有什么好吹得。”
+Hearing Xi Yazhou's introduction, He Ming waved his hand: "Little Xi, what's the point of saying all this! What's there to brag about a soldier fighting a war?"
 
-　　看起来老一辈的军人里还是实诚人多。[萧子山][y001]想。
+*It seems there are still many honest people among the older generation of soldiers,* [Xiao Zishan][y001] thought.
 
-　　“穿越者中的多数人，对军事都是外行。”[文德嗣][y002]斟酌着语句，“不少人对武器装备和军事理论了解很多很深，但是毕竟都是纸上谈兵，真正当过兵，摸过枪得人不多。所以想听一下体育组的想法，你们毕竟是专业人员的。”
+"Most of the transmigrators are laymen when it comes to military affairs," [Wen Desi][y002] chose his words carefully. "Many people have a lot of deep knowledge about weapons, equipment, and military theory, but it's all on paper. There aren't many who have actually served in the army and handled a gun. So I want to hear the thoughts of the Sports Group. You are the professionals, after all."
 
-　　“嗯，我想先确认一下大概会有多少人来参加穿越？退伍转业军人、基干民兵比例是多少？”
+"Well, I want to first confirm roughly how many people will participate in the transmigration. What is the proportion of demobilized and transferred military personnel and core militia?"
 
-　　“目前不大好说，最终可能有五百到六百人。有你说的资格的人大约还有十名。”
+"It's hard to say at the moment. In the end, there may be five to six hundred people. There are about ten more people with the qualifications you mentioned."
 
-　　“那我们还是要走全民皆兵的路线了。”席亚洲说，“这样的人口基数不可能维持一支稍具规模的专门武装的。”他顿了一下，“十四个人，哪怕都是兰博也不够用。我们得全面军训。所有人都参加。”
+"Then we still have to take the route of making every citizen a soldier," Xi Yazhou said. "Such a population base cannot sustain a specialized armed force of any significant size." He paused for a moment. "Fourteen people, even if they are all Rambos, are not enough. We need to conduct comprehensive military training. Everyone must participate."
 
-　　“连女人？”
+"Even the women?"
 
-　　“对，连女人，不过那位[田大妈][y110]就不用了。男人不分年龄，女人四十以下的。”
+"Yes, even the women, but that [Auntie Tian][y110] doesn't need to. Men of all ages, and women under forty."
 
-　　“训练什么呢？”[萧子山][y001]想不会是大学军训的那些内容吧。
+"What will the training be?" [Xiao Zishan][y001] wondered if it would be the same content as university military training.
 
-　　“这个我们会定一个训练计划的。”席亚洲想了想，“毕竟我们要面临的环境完全不同。所以科目要做一些删改。初步就是队列、简易土工作业、长、短各一种轻武器的拆装和实弹射击，还有简单的格斗术。”
+"We will set a training plan for this." Xi Yazhou thought for a moment. "After all, the environment we will be facing is completely different. So the subjects need to be revised. The preliminary plan is drill, simple earthwork, disassembly and assembly and live-fire shooting of one long and one short light weapon, and simple fighting techniques."
 
-　　“先组建一个以退伍军人为主的15－20人小队，负责前期的警戒和侦察工作——这个算我们的常备军。体育组再吸收一些身体条件比较好的年轻人做全面一些的军事训练。规模大概为五十人，作为基干民兵。”
+"First, we will form a small team of 15-20 people, mainly composed of veterans, to be responsible for early warning and reconnaissance work—this will be our standing army. The Sports Group will then recruit some young people with better physical conditions for more comprehensive military training. The scale will be about fifty people, as the core militia."
 
-　　“这些人不能脱产。”
+"These people cannot be taken away from production."
 
-　　“当然，”席亚洲说，“所以说是基干民兵，训练内容多一些而已，战斗的时候作为骨干力量。”
+"Of course," Xi Yazhou said, "that's why they are called the core militia. They will just have more training content and will serve as the backbone force in battle."
 
-　　“时间呢？”
+"What about the time?"
 
-　　“基本训练是三十天，基干民兵九十天，如果有好苗子我想一直训练到穿越。”席亚洲拿铅笔算了算，“另外体能训练要一直开展——至少每天进行长跑锻炼。体育组专门负责做这些事情，就是武器拆装和实弹训练得另外找地方，这边射击俱乐部多吗？”
+"Basic training is thirty days, and ninety days for the core militia. If there are good prospects, I would like to train them continuously until the transmigration." Xi Yazhou calculated with a pencil. "In addition, physical training must be carried out continuously—at least long-distance running every day. The Sports Group will be specially responsible for these things. It's just that we need to find another place for weapons disassembly and live-fire training. Are there many shooting clubs here?"
 
-　　“好像本县就有一个，专门吸引香港人来玩得。”
+"It seems there is one in this county, specifically to attract people from Hong Kong to play."
 
-　　“那好。可惜枪不好搞。”席亚洲叹了口气，“俱乐部里的子弹又太贵了，只能让大家熟悉下感觉，根本练不出什么来。”
+"That's good. It's a pity that guns are not easy to get." Xi Yazhou sighed. "And the ammunition in the club is too expensive. We can only let everyone get a feel for it, we can't really train anything."
 
-　　[萧子山][y001]不安的移动了一下身子，他预感到下面要谈一些极敏感的问题了。一瞬间他想自己是不是该借口上厕所溜出去。
+[Xiao Zishan][y001] shifted uncomfortably. He had a premonition that they were about to discuss some extremely sensitive issues. For a moment, he thought about whether he should excuse himself to go to the toilet and slip away.
 
-　　“武器上的问题的确很困难，这东西太敏感了。”
+"The problem of weapons is indeed very difficult. This thing is too sensitive."
 
-　　“能搞到真正的枪么？”[王洛宾][y003]不死心，虽说他号称做过N支枪，但这毕竟都是一般钢材做的，和真正兵工厂出来的枪支还是有极大的区别。
+"Can we get real guns?" [Wang Luobin][y003] hadn't given up hope. Although he claimed to have made N guns, these were after all made of ordinary steel, and there was a huge difference from the guns that came out of a real arsenal.
 
-　　现代的枪支使用的材料种类繁多，仅不同型号钢材就有十多种之多。
+Modern firearms use a wide variety of materials, with more than ten different types of steel alone.
 
-　　“可以。”席亚洲稍微有点了解这方面的情况，“不过还是别去动这样的脑筋，出事的可能性很大。”
+"It's possible," Xi Yazhou knew a little about this. "But it's better not to think about it. The possibility of something going wrong is very high."
 
-　　“那就只能指望工业组自己造了。”[王洛宾][y003]有点失望。
+"Then we can only count on the Industrial Group to build them themselves," [Wang Luobin][y003] was a little disappointed.
 
-　　“就在本时空造么？”
+"Are we going to build them in this time-space?"
 
-　　“我们有设备、有人才，材料也不难买到。做出来的东西比起化隆造只好不差。”
+"We have the equipment, the talent, and the materials are not difficult to buy. The things we make will be no worse than those made in Hualong."
 
-　　[文德嗣][y002]连连摇头：“这太危险了，黑枪是重点打击的对象。真搞起来，用不了几天警察叔叔就得找上门来”
+[Wen Desi][y002] shook his head repeatedly: "This is too dangerous. Illegal firearms are a key target for crackdowns. If we really do it, the police will come knocking in a few days."
 
-　　“那怎么办？我们没可能弄到武器的。”
+"Then what do we do? We have no way to get weapons."
 
-　　“从射击俱乐部用狗换一些真铁出来怎么样？”有人异想天开了。
+"How about trading some 'dogs' (airsoft guns) for some real iron at a shooting club?" someone had a wild idea.
 
-　　“那你还不如直接去偷人武部！”[萧子山][y001]不得不强烈的表示反对。
+"You might as well just go and steal from the People's Armed Forces Department!" [Xiao Zishan][y001] had to strongly object.
 
-　　“[文总][y002]，现在能搞到多少武器，你交个底吧。我好心中有数。”
+"[Chief Wen][y002], how many weapons can we get now? Give me the bottom line, so I have an idea."
 
-　　[文德嗣][y002]犹豫了一下，眼下藏个狗都保不定要吃官司更不用说这样的真铁了。不过席亚洲是未来的军事班底，这点信任度的表示还是要有的。
+[Wen Desi][y002] hesitated for a moment. At present, even hiding an airsoft gun could lead to legal trouble, let alone real firearms. But Xi Yazhou was the future military backbone, and this show of trust was necessary.
 
-　　“东西很少。”这些数字[文德嗣][y002]从来不记在本子或者笔记本里，全凭脑子记。
+"There are very few items." [Wen Desi][y002] never wrote down these numbers in a notebook or laptop; he memorized them all.
 
-　　目前能够确认的一共有十多支不同牌子、口径和型号的猎枪，有老式的单发猎枪，也有经常上社会新闻的五连发，口径有12号、16号和20号的。全是国产的老牌子，如鸽、鹰、飞龙和双环之类的，都是过去的狩猎爱好者的留存，弹壳、底火、子弹装填器之类的配件齐全，就是枪龄普遍较老，有的甚至有三十年以上的历史了。
+Currently, they could confirm a total of more than ten shotguns of different brands, calibers, and models. There were old-fashioned single-shot shotguns, as well as the five-shot pump-actions that often appeared in social news. The calibers were 12, 16, and 20 gauge. They were all old domestic brands, such as Pigeon, Eagle, Flying Dragon, and Double Ring. They were all leftovers from past hunting enthusiasts. The accessories such as shells, primers, and bullet loaders were complete, but the guns were generally old, some even with a history of more than thirty years.
 
-　　真正可以算是步枪的，是二支峨嵋牌小口径运动步枪，枪况良好，比赛用瞄准具之类的配件一应俱全，还有少量的弹药。
+What could truly be considered rifles were two Emei brand small-caliber sporting rifles. The guns were in good condition, with a full set of accessories such as competition sights, and a small amount of ammunition.
 
-　　不知牌号东德产线膛猎枪一支，使用一种8*57mm弹，有几个弹壳，无弹药。
+There was also one unbranded East German-made rifled hunting gun that used an 8x57mm cartridge. There were a few casings, but no ammunition.
 
-　　另有上海牌和工字牌64若干支，其中一支上海牌64是比赛用枪，有瞄准具。
+In addition, there were several Shanghai brand and Gongzi brand Type 64 air rifles, one of which was a competition gun with a sight.
 
-　　“没一支真正的枪。”有人比较失望。
+"Not a single real gun," someone was rather disappointed.
 
-　　“很不错了。猎枪霰弹可以打35米，用独头弹射程70米，比起燧发枪来毫不逊色，比火绳枪更是超越了不止一个时代。而且发射速度是我们的优势。”席亚洲显然没有对这些乱七八糟的武器失望，“小口径运动步枪精度很好，又有瞄准具，可以作为狙击枪使用，远程压制敌人重要目标。我记得小口径步枪有效射程200米是完全能达到的。”
+"It's pretty good. Shotgun pellets can reach 35 meters, and with slugs, the range is 70 meters. It's not inferior to a flintlock, and it's more than a generation ahead of a matchlock. And our rate of fire is our advantage." Xi Yazhou was clearly not disappointed with these miscellaneous weapons. "The small-caliber sporting rifle has good accuracy and a sight. It can be used as a sniper rifle to suppress important enemy targets at long range. I remember that the effective range of a small-caliber rifle can definitely reach 200 meters."
 
-　　“杀伤力不大吧？敌人多半是全身铠甲啊。”
+"The lethality isn't great, is it? The enemy will most likely be in full armor."
 
-　　“哪有这么多铠甲，就破号衣一件。”
+"How can there be so much armor? Just a tattered uniform jacket."
 
-　　“那是满清，我大明可没这么寒碜……”
+"That's the Manchus. Our Great Ming is not so shabby..."
 
-　　有人要为盔甲的问题开始争论而且很没干货的立马扯到了明粉清黑上去的时候，墙角边传来一句不高的声音：
+Just as someone was about to start arguing about the armor issue and was about to senselessly drag it into a Ming-fan-versus-Qing-hater debate, a quiet voice came from the corner of the wall:
 
-　　“打脑袋就行。”
+"Just shoot them in the head."
 
-　　这是北炜——一个身材敦实的前侦察兵，从会议开始就一直面无表情地坐在那里。此刻大家都打了个寒颤。
+It was Bei Wei—a stocky former reconnaissance soldier who had been sitting there with a blank expression since the beginning of the meeting. At this moment, everyone shivered.
 
-　　席亚洲点点头：“敌人是什么样的装备水平，这个要历史爱好者去考据了，情报组要给我们一个明末的各方势力武力状况表：包括各自的战力、武器装备、战术战法、经典战例之类，这样我们能作有针对性的方案。”
+Xi Yazhou nodded: "What kind of equipment level the enemy has, this needs to be researched by the history enthusiasts. The Intelligence Group needs to give us a table of the military strength of all forces in the late Ming Dynasty: including their respective combat effectiveness, weapons and equipment, tactics and methods, classic battle examples, and so on. This way we can make targeted plans."
 
-　　“没问题。”情报组的人立刻答应了。
+"No problem," the people from the Intelligence Group immediately agreed.
 
-　　接着大家把细节再复了一遍，武器的事情比较复杂，决定先做一些情报收集再考虑解决的方案。
+Then everyone went over the details again. The matter of weapons was rather complicated, and they decided to do some intelligence gathering first before considering a solution.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
