--- a/_posts/2009-9-24-1-02400.md
+++ b/_posts/2009-9-24-1-02400.md
@@ -1,116 +1,117 @@
 ---
 layout: post
-title: 第二十四节 高举的烦恼
+title: "Section 24: Gao Ju's Troubles"
 category: 1
 path: 2009-9-24-1-02400.md
 tag: [normal]
 ---
 
-　　天气一点都不热，现在又是早晨，可是高举却在流汗。
+The weather was not hot at all, and it was morning, yet Gao Ju was sweating.
 
-　　别误会，高老爷虽然人到中年，身材难免有些发福，却还是很健壮的一个男人。并非虚乏得要进补才能应付小妾的那类面团团富家翁。
+Don't get me wrong. Although Master Gao was middle-aged and his figure had inevitably put on some weight, he was still a very robust man, not the kind of doughy rich man who needed supplements to handle his concubines.
 
-　　胳膊上不一定跑过马，不过也曾经面对过几十柄刀剑火枪面不改色，这么个人物，却在一个并不炎热的晚春午间流冷汗。
+He might not have been able to have a horse run on his arm, but he had once faced dozens of swords and muskets without changing his expression. Such a man was now breaking out in a cold sweat on a not-so-hot late spring afternoon.
 
-　　早一个月间，就接到杨公公的信，说已经派了义子——杨天梁来广州，有要事和他相商。高举实在吃不准这要事是什么事，心里直打鼓。
+A month ago, he had received a letter from Eunuch Yang, saying that he had already sent his adopted son, Yang Tianliang, to Guangzhou to discuss important matters with him. Gao Ju was really not sure what this important matter was, and his heart was pounding.
 
-　　白白给这个太监剥去一半的出息，每每让他肉痛不已，但是这些年来也是靠了杨公公的庇护，一路有惊无险的过来了。因此每年利息分红，他都是一文钱都不少的送去京城里或是按他的吩咐存进广州的当铺里。
+To have half of his profits stripped away by this eunuch for nothing made his heart ache every time, but over the years, it was also thanks to Eunuch Yang's protection that he had come through with some scares but no danger. Therefore, every year, for the interest and dividends, he would send every single penny to the capital or deposit it in a pawnshop in Guangzhou as he was instructed.
 
-　　每年他夏送荔枝，冬进珍味，一天也没敢怠慢过这位大太监，怎么忽然派来个小杨公公来和他商量什么大事？
+Every year, he sent lychees in the summer and delicacies in the winter, and he had not dared to neglect this grand eunuch for a single day. Why did he suddenly send a Little Eunuch Yang to discuss some important matter with him?
 
-　　大事？高举苦笑起来，他一介商人而已，有什么大事能和这种宫里大爷商量。无非又是要他拿出一大笔款子来“暂用”、“报效”。而且数目十分巨大，否则不过是一纸书信的事情，巴巴的派了个“义子”过来——看来杨公公是急得很！他唉叹了一声，几个月前天上掉下来的外财，又得吐出去了。
+Important matter? Gao Ju smiled bitterly. He was just a merchant. What important matter could he discuss with such a grandee from the palace? It was nothing more than asking him to take out a large sum of money for "temporary use" or "repayment of favor." And the amount would be very large, otherwise it would just be a matter of a letter. To send an "adopted son" all the way here—it seemed Eunuch Yang was very anxious! He sighed. The windfall that had fallen from the sky a few months ago would have to be spat out again.
 
-　　破点钱财不是他最害怕的事情。自从天启年来九千岁得势，宫里的事情就得愈发深不可测。他的靠山杨公公出自高时明的门下，这位高太监天启元年为了自保很识相的自动辞职了。杨公公眼下在宫里也属于靠边站的人物。
+Losing some money was not what he feared most. Since the Nine-Thousand-Year-Old came to power in the Tianqi reign, matters in the palace had become even more unfathomable. His backer, Eunuch Yang, was a protégé of Gao Shiming. This Grand Eunuch Gao had wisely resigned in the first year of Tianqi to protect himself. Eunuch Yang was now a marginalized figure in the palace.
 
-　　假如九千岁看杨公公不顺眼？高举不由得吓出一身冷汗，他一点都不喜欢杨公公——奈何这么多年来彼此的利用关系已经把他们拴在了一起——就好像一根绳上的二只蚂蚱。杨公公今天完了，明天东厂的番子就会来撞他家的大门，破家灭门的奇祸立至。
+What if the Nine-Thousand-Year-Old took a dislike to Eunuch Yang? Gao Ju couldn't help but break out in a cold sweat. He didn't like Eunuch Yang at all—but over the years, their relationship of mutual exploitation had tied them together—like two grasshoppers on the same rope. If Eunuch Yang was finished today, the agents of the Eastern Depot would come knocking on his door tomorrow, and the disaster of his family's ruin would be imminent.
 
-　　这回，别是为了这事吧？高举又开始出汗，不由得吼了一声：
+This time, could it be about this matter? Gao Ju started sweating again and couldn't help but roar:
 
-　　“打扇！”
+"Fan me!"
 
-　　书房里伺候的丫鬟赶紧在旁的罗扇轻摇，微风轻送，还夹杂着一缕脂粉女体的香气，要是平时，多烦躁的心情也能平和起来，这会却不成，只觉得浑身燥热，猛得从榻上竖其身来，骂道：
+The maid serving in the study quickly began to wave the round fan by her side. A gentle breeze blew, mixed with a wisp of the fragrance of cosmetics and a woman's body. Normally, even the most restless mood would be calmed, but at this moment, it was no use. He only felt hot all over, and suddenly sat up straight from the couch, cursing:
 
-　　“都给我滚出去！”
+"All of you, get out!"
 
-　　屋子里的丫鬟小厮都吓了一跳，赶紧缩脖弯腰的退了下去。
+The maids and pages in the room were all startled and quickly bowed their heads and retreated.
 
-　　正耐了片刻，却听有人禀报：
+After enduring it for a moment, he heard someone report:
 
-　　“阎管事来了。”
+"Manager Yan is here."
 
-　　“叫他进来。”
+"Let him in."
 
-　　阎管事是来通禀说高青适才来报，澳洲海商们已经到了。
+Manager Yan had come to report that Gao Qing had just sent word that the Australian sea merchants had arrived.
 
-　　“已经到了？”高举眼睛一转，这还算是个好消息。多少给了他一些欣快的感觉。毕竟看见送钱来得总是愉快的。最近他们已经不再要瓷器，多要各种名贵药材香料，也有采买各种硬木檀木料的。很让高举疑惑：东西不难买，广州城里多的是——问题是这些货物十有八九是西洋（郑和下西洋的西洋，非后来的意思）所产，但凡外国海商都有贩运，为什么巴巴的又要他去代买？这让他对这群海商的来头愈发感到奇怪。
+"They've arrived?" Gao Ju's eyes darted around. This was still some good news. It gave him some sense of euphoria. After all, seeing people who brought money was always pleasant. Recently, they had stopped asking for porcelain and were mostly asking for various precious medicinal herbs and spices, and also purchasing various hardwoods and sandalwood. This made Gao Ju very puzzled: the things were not difficult to buy, and there were plenty in Guangzhou—the problem was that nine out of ten of these goods were produced in the West (the West of Zheng He's voyages, not the later meaning). All foreign sea merchants transported them. Why did they insist on having him buy them on their behalf? This made him even more curious about the origins of this group of sea merchants.
 
-　　这高青也是废物，过去伺候了二个多月，什么东西也没探查出来。不过他本来也没指望这个木呆呆的汉子能探听出什么来。
+This Gao Qing was also useless. He had served for more than two months and had not found out anything. But he hadn't expected this dull-witted man to be able to find out anything anyway.
 
-　　眼下顾不得这许多，哼了一声，问：
+For now, he couldn't be bothered with all this. He snorted and asked:
 
-　　“货收得怎么样了，有什么新货么？”
+"How is the receiving of the goods? Are there any new goods?"
 
-　　“回老爷的话，没有新货，小的们正在点看数字。”
+"Replying to master, there are no new goods. We are currently counting the numbers."
 
-　　“好，请他们过来叙话吧。”
+"Alright, invite them over for a talk."
 
-　　“澳洲的老爷们还带了一位……嗯，客商过来，”阎管事不知道怎么称呼这次多出来的人，也不知道算是从人伙计还是平起平坐的商贾。
+"The Australian masters also brought a... um, a merchant with them," Manager Yan didn't know how to address the extra person this time, not knowing if he was a servant, an assistant, or a merchant of equal standing.
 
-　　“一并请就是。”
+"Just invite them all."
 
-　　“小的明白，”阎管事踏上一步，小声禀道，“这次新来的人貌似是练家子。老爷是否？”
+"I understand," Manager Yan took a step forward and reported in a low voice, "The new person this time seems to be a martial artist. Should master?"
 
-　　“嗯。”高举略一沉吟觉得无此必要，不过阎管事这番思虑也是忠心护主，便吩咐，“你传话，叫赵教头带几个护院在院子里伺候。不可露相。”
+"Hmm." Gao Ju pondered for a moment and felt it was unnecessary, but Manager Yan's consideration was also out of loyalty to protect his master, so he instructed, "You pass the word, tell Instructor Zhao to bring a few guards to wait in the courtyard. Do not show yourselves."
 
-　　“是，小的明白。”阎管事见他并无其他吩咐，便要退了出去。
+"Yes, I understand." Seeing that he had no other instructions, Manager Yan was about to withdraw.
 
-　　“慢着，去韶州的人还没传回消息？”
+"Wait, has there been no news from the people sent to Shaozhou?"
 
-　　“没有。小杨公公是三月初二才出得京城，这会估计还没到南安府地界。左右再有十天也到了。”
+"No. Little Eunuch Yang only left the capital on the second day of the third month. He probably hasn't even reached the territory of Nan'an Prefecture yet. He should be here in about ten more days."
 
-　　“叫书启上的师爷们，把所有和杨公公有关的来往的书信都找出路拆看一遍，查查小杨公公的路数，年龄多大，哪年认得义子，有什么嗜好，统统给我找出来。”
+"Tell the secretaries in the correspondence office to find all the letters to and from Eunuch Yang, open them up and read them again. Find out Little Eunuch Yang's background, how old he is, in what year he was adopted, what his hobbies are, find out everything for me."
 
-　　“是，老爷。”
+"Yes, master."
 
-　　“有新的朝报来了么？”
+"Have any new court gazettes arrived?"
 
-　　“书启上的师爷们没说，应是没有。四月的只有一份急选报。都是任官的消息，便没呈进来……”
+"The secretaries in the correspondence office didn't say, so there probably aren't any. There was only one urgent selection report for the fourth month. It was all news of official appointments, so it wasn't presented..."
 
-　　“什么混帐话，快传人去取来！”这急选报不同于一般的邸报，乃是吏部调补官吏的名单，虽然没什么方面大员，不过叶落知秋，小官吏的职位变动或许也能看出些朝廷的风向来。
+"What nonsense! Quickly send someone to fetch it!" This urgent selection report was different from the ordinary court gazette. It was a list of officials appointed by the Ministry of Personnel. Although there were no high-ranking officials, one could know the autumn by a falling leaf. The change in the positions of minor officials might also reveal some of the court's political direction.
 
-　　吩咐完事情，又喝了几口茶，定了定心神。便起身去外书房会客了。
+After giving his instructions, he drank a few more sips of tea to calm himself down. Then he got up and went to the outer study to meet his guests.
 
-　　北炜是第一次穿过虫洞，眼下在这明朝人的屋子里，恍若做梦一般。
+It was Bei Wei's first time through the wormhole. At this moment, in the house of a Ming Dynasty person, it was as if he were in a dream.
 
-　　当侦察兵是很久之前的事情，退伍之后不管干什么，都还努力的保持着过去学到的技能。他这次参加穿越贸易，重点就是对未来广州的地下活动进行一次简单的参谋旅行。
+It had been a long time since he was a reconnaissance soldier. After leaving the army, no matter what he did, he still tried hard to maintain the skills he had learned in the past. His participation in the transmigration trade this time was mainly to conduct a simple staff tour for the future underground activities in Guangzhou.
 
-　　高老爷是他们的合作者，但还仅仅是合作者。既然是单纯的趋利的合作，在任何时候他都可能背叛穿越众，这事不可不防。
+Master Gao was their collaborator, but he was still just a collaborator. Since it was a cooperation purely for profit, he could betray the transmigrators at any time. This was something they had to guard against.
 
-　　如果有其他势力介入其中，出于自己的目的要危害到高老爷，造成他们的合作不能持续，出于保护合作者，保护这条渠道的目的，也要事先做好准备。
+If other forces intervened and, for their own purposes, were to harm Master Gao, causing their cooperation to be unsustainable, they also had to be prepared in advance to protect their collaborator and this channel.
 
-　　北炜从离开广州分部的后门开始，一直到走进高宅，便以一种奇特的僵硬步伐走路，每一步都是标准的八十厘米。他的随身包里装着一台便携式的摄像机，自动拍摄走过的环境，而比这个更可靠的就是他的眼睛和大脑：记录着走过的每个门户，每个院子，哪里转弯，哪里有门……
+From the moment he left the back door of the Guangzhou branch until he walked into the Gao residence, Bei Wei walked with a strange, stiff gait, each step a standard eighty centimeters. In his carry-on bag was a portable video camera, automatically filming the environment he passed through. But more reliable than this were his eyes and his brain: recording every gate, every courtyard he passed, where he turned, where there was a door...
 
-　　府里无关的仆佣都被阎管事差遣开了，这个新来的澳洲人的奇怪做派却还是让几个带路护送的家丁窃窃私语。不过他们也很羡慕那健壮的体魄——一般的家丁，怕都没法在他手下过三招吧。
+The irrelevant servants in the residence had all been sent away by Manager Yan, but the strange behavior of this new Australian still made the few servants who were guiding and escorting them whisper among themselves. However, they were also envious of his strong physique—an ordinary servant would probably not last three moves against him.
 
-　　宾主双方此刻正在客套。为了避免不必要的应酬，出发前便已定好：北炜是作为澳洲海商带来的护卫身份，因此只端坐在[文总][y002]的身后，双手扶膝，纹丝不动。眼睛却在审视四面八方。
+The host and guests were currently exchanging pleasantries. To avoid unnecessary socializing, it had been decided before departure: Bei Wei was acting as a guard brought by the Australian sea merchants, so he just sat upright behind [Chief Wen][y002], his hands on his knees, motionless. But his eyes were surveying all directions.
 
-　　虽说叫外书房，实则乃是一个完整的小院落，这个厅也不小。北炜眼神一扫，知道厅内共有十一个明人：那个高老爷、一个带路的管事、一个护卫、二个伺候的丫头、二个小厮，另外有四个家丁在厅内四角。
+Although it was called the outer study, it was actually a complete small courtyard, and this hall was not small. Bei Wei's eyes swept around, and he knew that there were a total of eleven Ming people in the hall: that Master Gao, a manager who led the way, a bodyguard, two serving maids, two pages, and another four servants in the four corners of the hall.
 
-　　四个家丁身材匀称，个小而健壮，不问可知就是高家的护院了。他们的衫子稍嫌肥大，怕都是内藏铁尺之类的家伙。
+The four servants were well-proportioned, small but sturdy. It was obvious they were the Gao family's household guards. Their shirts were a bit too loose, probably concealing weapons like iron rulers.
 
-　　这还只是一部分。北炜从进到这个院子就发现，在院子里的假山、树后，还不起眼地站着了另外四个护卫。
+This was only a part of it. From the moment he entered this courtyard, Bei Wei had discovered that behind the rockeries and trees in the courtyard, there were another four guards standing inconspicuously.
 
-　　真正的高手，恐怕就是那个站在高老爷身后，控制着通向侧面厢房门的护卫了。一身青色箭袖衣，垂手默立，身上却有一股微露的砺气。
+The real expert was probably the bodyguard standing behind Master Gao, controlling the door leading to the side room. He was dressed in a green arrow-sleeved robe, standing silently with his hands down, but there was a faint aura of sharpness about him.
 
-　　不知道这些明代武林高手到底有多厉害。北炜心痒痒得，若有机会和他们搏击一回他是不会错过的。他对中国传统武术很有兴趣，在部队里学习的格斗以现代搏击为主，传统武术涉猎不多。他也去观摩过一些武术表演，总觉得不过瘾：里面花拳绣腿的成分太多，真正的实战技术没有表现出来。
+He didn't know how powerful these Ming Dynasty martial arts masters really were. Bei Wei was itching for a fight. If he had the chance to fight them once, he would not miss it. He was very interested in traditional Chinese martial arts. The fighting skills he learned in the army were mainly modern combat, and he had not dabbled much in traditional martial arts. He had also observed some martial arts performances, but always felt that they were not satisfying: there was too much flowery and impractical stuff, and the real combat techniques were not shown.
 
-　　高老爷和[文德嗣][y002]继续着他们的生意经，二个人都有点心不在焉。一个是在想杨公公的事情，另一个，则在考量广州分舵的扩展。
+Master Gao and [Wen Desi][y002] continued their business talk, both a little absent-minded. One was thinking about Eunuch Yang's affairs, the other was considering the expansion of the Guangzhou branch.
 
-　　[文德嗣][y002]这次来的主要目的，就是扩建这个广州分舵。
+[Wen Desi][y002]'s main purpose in coming this time was to expand this Guangzhou branch.
 
-　　目前的打下的基础已经不错，但是还是太封闭。他们的全部对外交流全部是通过高举进行的，这种态势对未来的贸易和情报工作开展不利。执委会的一个想法就是要尽量的“走出去”，发展更多的代理人——不仅是高老爷这样的商贾，还包括官吏、读书人、普通百姓。
+The current foundation was already good, but it was still too closed. All their external communication was conducted through Gao Ju. This situation was not conducive to the future development of trade and intelligence work. One of the Executive Committee's ideas was to "go out" as much as possible and develop more agents—not just merchants like Master Gao, but also officials, scholars, and ordinary people.
 
-　　当然此时还做不到，他们的样子古怪，语音奇特，出去就是被人围观的命，不过高举送给他们的一房家人，却给了他们另外一个机会。只要能收拢高青一家的人心，以后的道路，就会越走越宽广。
+Of course, this was not yet achievable. Their appearance was strange, and their speech was peculiar. If they went out, they would be surrounded by onlookers. But the family of servants that Gao Ju had given them provided them with another opportunity. As long as they could win the hearts of Gao Qing's family, the road ahead would become wider and wider.
 
-　　会谈很快便结束了，交割了双方的货单，这笔交易就算成了，货物银两，自然有人会运送，不劳他们费心。高老爷急于要去书房看书启师爷们整理出来的资料，也无心客套留饭，便命人送了一桌酒席过去。
+The meeting ended quickly. The cargo lists of both sides were handed over, and the deal was considered done. The goods and silver would naturally be transported by someone, so they didn't have to worry about it. Master Gao was anxious to go to the study to read the materials compiled by the secretaries, and was not in the mood for pleasantries or to keep them for a meal, so he ordered a banquet to be sent over.
+
 [y002]: /characters/y002 "文德嗣"
