--- a/_posts/2009-9-25-1-02500.md
+++ b/_posts/2009-9-25-1-02500.md
@@ -1,192 +1,192 @@
 ---
 layout: post
-title: 第二十五节 恩威并重
+title: "Section 25: A Balance of Kindness and Power"
 category: 1
 path: 2009-9-25-1-02500.md
 tag: [normal]
 ---
 
-　　这一天余下的时间，来的四个人过得很充实，高老爷送来的一桌酒席，上的是“大四件”，十二道菜。
+The rest of the day was very fulfilling for the four who had arrived. The banquet sent by Master Gao was a "grand four-piece set," with twelve dishes.
 
-　　菜式和现代的粤菜不大一样，但胜在原料天然，又精心烹调，甘鲜腴润，特别是一味西施舌浓羹，吃得几个人连连点头。
+The style of the dishes was not quite the same as modern Cantonese cuisine, but its strength lay in the natural ingredients and meticulous cooking. It was sweet, fresh, rich, and moist. In particular, a thick soup of Xishi's tongue made the several of them nod in approval again and again.
 
-　　北炜想这当领导就是好啊，这样到明朝腐败的机会一般群众哪里享受得到。正想着，高青的妻子高纤从厨下端了重新热过的主菜上来，却是满满一盘鸽蛋大小的肉丸，浸在浅浅的清汤里，柔脂晶莹，上面洒了碧绿的葱花。
+Bei Wei thought to himself, *it's good to be a leader. How could the common masses enjoy such an opportunity for corruption in the Ming Dynasty?* Just as he was thinking, Gao Qing's wife, Gao Xian, brought up the reheated main course from the kitchen. It was a full plate of meatballs the size of pigeon eggs, soaked in a shallow clear soup, tender and glistening, sprinkled with green chopped scallions.
 
-　　[文德嗣][y002]先拿起勺子，送了一个在口中，一咬下去，清鲜满口，回味中还微微带着花椒的麻辣。[文总][y002]在本时空也是场面上厮混过的人物，虽不是三日一小宴五日一大宴，吃饭的经验却是穿越众里数一数二的。这一口却吃不出是什么东西做的，感觉上去即有鸡肉的又有水产。问道：
+[Wen Desi][y002] was the first to pick up a spoon and put one in his mouth. With one bite, a fresh and clean taste filled his mouth, with a faint numbing spice of Sichuan pepper in the aftertaste. [Chief Wen][y002] was a man who had seen his share of social occasions in his own time. Although he wasn't having small banquets every three days and large ones every five, his experience with food was second to none among the transmigrators. Yet, with this one bite, he couldn't tell what it was made of. It felt like it had both chicken and seafood. He asked:
 
-　　“这是什么东西？”
+"What is this?"
 
-　　“这是水陆珍。”高纤轻声说，“是用黄甲肉、大银鱼、鸡肉、田鸡、白虾一起拌和了做的。老爷可喜欢？”
+"This is a treasure of land and sea," Gao Xian said softly. "It's made by mixing turtle meat, large silverfish, chicken, frog, and white shrimp together. Does master like it?"
 
-　　“好，真是好味道。”
+"Good, it's truly a good taste."
 
-　　“嗯嗯，的确不错。”
+"Mmm, mmm, it's indeed not bad."
 
-　　“地主就是过得腐朽啊。”说这话的[王工][y003]一脸羡慕，明显属于欲腐朽而不得的表情。
+"Landlords really live a decadent life," said [Engineer Wang][y003] with a look of envy, clearly an expression of wanting to be decadent but being unable to.
 
-　　“做个丸子也这么得瑟！”北炜撇了下嘴。
+"Making such a fuss over a meatball!" Bei Wei pursed his lips.
 
-　　“这些菜里几乎每个都放花椒，把本来很好的味道都有些破坏了。”[文德嗣][y002]摇摇头，似乎觉得可惜，“原料那么新鲜，又是纯天然的……”
+"Almost every one of these dishes has Sichuan pepper in it, which has somewhat ruined the originally very good taste." [Wen Desi][y002] shook his head, seeming to find it a pity. "The ingredients are so fresh, and they are purely natural..."
 
-　　“这好像是明代烹饪的习惯。东南亚香料出口贸易里，大明也是重要的市场。”
+"This seems to be a habit in Ming Dynasty cooking. In the Southeast Asian spice export trade, the Great Ming is also an important market."
 
-　　“这个转口贸易可以做。”
+"This entrepôt trade can be done."
 
-　　正说着话，高纤又端来六个小碟，都是一些熏腊小食之类，用来助酒之物。过来烫酒，却见随酒席送来的一坛子金华酒动也未动，迟疑了一下问：
+As they were talking, Gao Xian brought over six small dishes, all of which were smoked and cured snacks, things to accompany wine. She came over to warm the wine, but saw that the jar of Jinhua wine that came with the banquet had not been touched. She hesitated for a moment and asked:
 
-　　“老爷们不用酒？”
+"Masters are not drinking wine?"
 
-　　“不用酒。”因为怕喝酒误事，他们在明朝时空是滴酒不沾的。
+"No wine." Because they were afraid that drinking would interfere with their work, they did not touch a drop of alcohol in the Ming Dynasty time-space.
 
-　　“老爷们即不愿用酒，奴婢自己蒸的花露，点了水用可好？”
+"Since the masters are unwilling to drink wine, how about some flower dew that I distilled myself, mixed with water?"
 
-　　“花露，花露水？”大家一征。
+"Flower dew? Like toilet water?" Everyone was taken aback.
 
-　　“是，都是奴婢自己蒸得，眼下只有稻叶和紫苏二种。老爷们若不嫌弃，请先尝尝。”
+"Yes, I distilled it all myself. Right now, I only have two kinds, rice leaf and perilla. If the masters don't mind, please try some."
 
-　　端出来一看原来就是用植物叶花蒸馏出来的香精油液体，明代的蒸馏酒工艺已经成熟，小型的蒸馏甑除了做烧酒，做花露也是一个重要的用途。
+When it was brought out, they saw that it was an essential oil liquid distilled from plant leaves and flowers. The distillation technology for alcohol was already mature in the Ming Dynasty, and besides making liquor, making flower dew was also an important use for small stills.
 
-　　兑上清水饮用，的确别有一股清香雅致的味道。
+When mixed with clean water and drunk, it indeed had a unique, fresh, and elegant taste.
 
-　　[萧子山][y001]心里却起了疑惑。这个高纤明明是佃户的老婆，在高家又是做粗使的女仆，却知道做花露，又懂做菜的食谱……他不由得仔细打量起这个女人来，发现她进退之间，举手投足都有一番风范，不像其夫那么笨拙。
+But a doubt arose in [Xiao Zishan][y001]'s heart. This Gao Xian was clearly a tenant farmer's wife, and a rough servant in the Gao family, yet she knew how to make flower dew and also knew the recipe for the dishes... He couldn't help but scrutinize this woman carefully, and found that in her movements, her every gesture had a certain grace, unlike her husband's clumsiness.
 
-　　有心探查一下，便叫住她问道：“高嫂子，你在府里当过差吧？”
+Wanting to investigate, he stopped her and asked, "Sister-in-law Gao, you have served in the main residence before, haven't you?"
 
-　　却见高纤一抖，低声道：“是，奴婢一直在高宅里……”
+Gao Xian trembled and said in a low voice, "Yes, this servant has always been in the Gao residence..."
 
-　　“不是吧，你在高宅是作粗作下人，怎么知道这水陆珍的食谱？又从哪里学来的做花露呢？”
+"That can't be right. You were a rough servant in the Gao residence. How do you know the recipe for this treasure of land and sea? And where did you learn to make flower dew?"
 
-　　高纤愈加慌乱，支吾道：“都是……都是姐妹们教的……叫老爷见笑了……”
+Gao Xian became even more flustered and stammered, "It was... it was taught by my sisters... I have made a fool of myself in front of the master..."
 
-　　“你多大了？”
+"How old are you?"
 
-　　“奴婢三十岁。”
+"This servant is thirty."
 
-　　[萧子山][y001]看着她那张虽然已经变得黝黑却依稀还能见到少女时的风韵的面孔，联想到高露洁的相貌，再想到这对夫妻相差的年龄，心里已经明白了八九分，不过此刻无需说破。
+[Xiao Zishan][y001] looked at her face, which, although it had become dark, still faintly showed the charm of her youth. He thought of Gao Lujie's appearance, and then of the age difference between the couple. He already understood eight or nine-tenths of the situation in his heart, but there was no need to expose it at this moment.
 
-　　沉吟了一下，望了望厅外。并无其他人，高青大概在后院做活。便道：
+He pondered for a moment and looked outside the hall. There was no one else. Gao Qing was probably working in the backyard. He then said:
 
-　　“这些日子，高青经常去高老爷那里么？”
+"These days, does Gao Qing often go to Master Gao's place?"
 
-　　“……”高纤猛得一惊，却不言语。[萧子山][y001]知道没错：高老爷一定常向高青打听他们的消息。
+"..." Gao Xian was suddenly startled, but said nothing. [Xiao Zishan][y001] knew he was right: Master Gao must often ask Gao Qing for news about them.
 
-　　“那阎管事也常来吧。”[萧子山][y001]只慢慢的问话。
+"That Manager Yan also comes often, right?" [Xiao Zishan][y001] just asked slowly.
 
-　　“没来过……只偶然……”
+"He hasn't come... only occasionally..."
 
-　　“到底是没来过，还是偶然？！”
+"So has he not come, or has he come occasionally?!"
 
-　　“是……偶然来过，只是熟人走动……”高纤硬着头皮撒谎道。她在这一波逼问下已经张皇失措。萧老爷的话暗示他什么都知道，包括她过去的事情，这，这怎么可能呢，正彷徨间，见[萧子山][y001]的面色渐渐拉了下来。心知不妙，扑通一声跪倒在桌前：
+"He... has come occasionally, just as an acquaintance visiting..." Gao Xian lied through her teeth. She was already in a state of panic under this wave of questioning. Master Xiao's words implied that he knew everything, including her past. This, how could this be possible? As she was hesitating, she saw [Xiao Zishan][y001]'s face gradually darken. Knowing that things were not good, she knelt down before the table with a thud:
 
-　　“奴婢该死，不该欺瞒老爷的……”
+"This servant deserves to die, I should not have deceived the master..."
 
-　　北炜曾经是红旗下的革命军人，怎么看得惯这样的事情，刚要说话，被[文德嗣][y002]拉住了。[萧子山][y001]的这番问话虽然突然，却也是他们收拢人心计划中的一部分。
+Bei Wei had been a revolutionary soldier under the red flag. How could he stand to see such a thing? Just as he was about to speak, he was stopped by [Wen Desi][y002]. Although [Xiao Zishan][y001]'s questioning was sudden, it was also part of their plan to win people's hearts.
 
-　　“是来过不少次吧？怕我们住的院子，他也进去看过了。”
+"He has come quite a few times, right? I'm afraid he has even gone into the courtyard where we live to have a look."
 
-　　“没有，没有。”高纤吓得脸色都变了。
+"No, no." Gao Xian was so scared her face changed color.
 
-　　“还和你们许诺了，说要是有一天我等回澳洲去了，便收你们回高家，可是么？！”
+"And he also made you a promise, saying that if one day we return to Australia, he will take you back into the Gao family, is that right?!"
 
-　　高纤浑身哆嗦——老爷们什么都知道！她不由得暗暗怨恨自己的男人没个主见。每次被阎管事连哄带吓就答应带他去搜检，虽然没察看到什么，但这可是背主的罪名！
+Gao Xian trembled all over—the masters knew everything! She couldn't help but secretly resent her husband for having no backbone. Every time Manager Yan cajoled and threatened him, he would agree to let him search the place. Although nothing was found, this was the crime of betraying one's master!
 
-　　“奴婢该死，都是奴婢男人不好……”高纤被[萧子山][y001]这番话吓得伏地请罪，一五一十把他们不在期间阎管事来的事情、说的话都讲了出来。
+"This servant deserves to die, it's all my husband's fault..." Gao Xian, terrified by [Xiao Zishan][y001]'s words, prostrated herself and begged for forgiveness, confessing everything about Manager Yan's visits and words while they were away.
 
-　　“奴才男人耳软心活，不合误听他人的混话，”高纤说着说着已带了哭腔，“求老爷看在他年龄大了又有腿疾，饶了他的家法，奴婢愿身受倍偿的。”
+"My husband has soft ears and a weak heart, and was wrongly misled by others' nonsense," Gao Xian said, her voice already choked with sobs. "I beg the master to consider his old age and his leg ailment, and spare him the family punishment. This servant is willing to receive double the punishment in his stead."
 
-　　大家听了和事先估计的也差不太多。见她为了丈夫苦苦哀告，也不由得内心恻然。不到旧社会真不知道新社会的甜啊。
+What they heard was not much different from what they had estimated beforehand. Seeing her plead so bitterly for her husband, they couldn't help but feel a sense of pity. One really doesn't know the sweetness of the new society until one has been in the old one.
 
-　　[萧子山][y001]有意等了许久，方才故意长叹一声：
+[Xiao Zishan][y001] deliberately waited for a long time before letting out a long sigh:
 
-　　“高大嫂，你们全家自拔到我们名下，我等可有对不起你们之事？”
+"Sister-in-law Gao, since your whole family has been assigned to our name, have we done anything to wrong you?"
 
-　　“折杀奴婢了。老爷们的仁厚，奴婢全家感恩不尽。”
+"You are too kind to this servant. My whole family is endlessly grateful for the masters' benevolence."
 
-　　“你家食用不足，我们给月米，孩子们大了没花销，又给了月钱。不求知恩图报。只图万里涉波到这里落脚能有个安稳之地休憩。可不想给人纤毫毕见的。”
+"Your family did not have enough to eat, so we gave you monthly rice. Your children are grown and have no spending money, so we gave them a monthly allowance. We do not ask for gratitude in return. We only hope to have a peaceful place to rest after traveling thousands of miles across the waves to get here. We do not want to be watched in every detail."
 
-　　高纤也不答话，只边抽泣边连连磕头。
+Gao Xian did not answer, only sobbed and kowtowed repeatedly.
 
-　　“起来吧。”
+"Get up."
 
-　　“奴婢不敢，请老爷对奴婢重重用家法以肃家规。”
+"This servant dares not. I ask the master to punish this servant heavily according to the family rules to uphold the family discipline."
 
-　　[萧子山][y001]想这女人还真是一套一套的，看来果然不是一般农民的妻子。
+[Xiao Zishan][y001] thought, *this woman really has her ways*. It seemed she was indeed not the wife of an ordinary peasant.
 
-　　“无规矩不成方圆。这事情你和高青虽有错，不过事前我们也没定过规矩，就算不知者不罪。起来吧”
+"Without rules, nothing can be accomplished. Although you and Gao Qing were at fault in this matter, we had not set any rules beforehand, so let's consider it ignorance is no crime. Get up."
 
-　　“谢老爷恩典。”高纤听出老爷的话已经转了口气，估计不会把他们赶走了。挨一顿扳子她是不怕的，就惹火了老爷怕被赶走，即使高老爷愿意收留，以后也不会有他们的好日子过。
+"Thank you for the master's grace." Gao Xian heard that the master's tone had changed, and estimated that they would not be driven away. She was not afraid of being beaten with a plank, but she was afraid of angering the master and being driven away. Even if Master Gao was willing to take them in, they would not have a good life in the future.
 
-　　“以后的事情，你可明白？”
+"As for future matters, do you understand?"
 
-　　“是，奴婢知道了。”
+"Yes, this servant knows."
 
-　　“我知道你不是小门小户的出身，见事明理比高青强得多。日后要好好的教他，知道进退！”
+"I know you are not from a humble background. You are much better at understanding things than Gao Qing. In the future, you must teach him well, to know when to advance and when to retreat!"
 
-　　“奴婢知道，知道。”高纤连连点头。
+"This servant knows, knows." Gao Xian nodded repeatedly.
 
-　　“只要用心办事，忠心事主，不管我们日后是不是回澳洲，都不会让你们没个结果。好自为之。”
+"As long as you serve with diligence and loyalty, whether we return to Australia in the future or not, we will not leave you without a proper outcome. Conduct yourselves well."
 
-　　“奴婢谢……”高纤又要跪下来谢恩，[萧子山][y001]阻住了——地主老爷的威风还是在大家面前少摆为好，“去把高弟叫来。”
+"This servant thanks..." Gao Xian was about to kneel down again to express her gratitude, but [Xiao Zishan][y001] stopped her—it was better to show less of the landlord master's authority in front of everyone. "Go and call Gao Di here."
 
-　　待到高纤出去了，[萧子山][y001]方转过头来，对大家说：“我的演技如何？”他急于扭转这厅上的气氛。他可不想给人留下作威作福的印象，演技，对，只是演技而已。
+After Gao Xian had left, [Xiao Zishan][y001] turned his head and said to everyone, "How was my acting?" He was anxious to change the atmosphere in the hall. He didn't want to give the impression of being domineering. Acting, yes, it was just acting.
 
-　　[文德嗣][y002]张大了嘴：“[子山][y001]你祖上真是贫农？”
+[Wen Desi][y002]'s mouth fell open: "[Zishan][y001], were your ancestors really poor peasants?"
 
-　　“当然是。”
+"Of course they were."
 
-　　“你简直是金马影帝啊。”[王工][y003]也赞叹起来。
+"You are simply a Golden Horse Best Actor," [Engineer Wang][y003] also exclaimed in admiration.
 
-　　“把人家女的吓得。过了吧。”北炜有点不忍心了。
+"You scared the woman. Wasn't that a bit much?" Bei Wei felt a little sorry for her.
 
-　　“是过了，不过要恩威并重，这点程度是起码的。”[萧子山][y001]点点头，“我们四周都是眼睛。不扭转这样的局面以后开展不了工作。”
+"It was a bit much, but to balance kindness and power, this level is the minimum." [Xiao Zishan][y001] nodded. "We are surrounded by eyes. If we don't turn this situation around, we won't be able to carry out our work in the future."
 
-　　[文德嗣][y002]说：“过去给他们好处是‘恩’，现在是显示‘威’的时候。”
+[Wen Desi][y002] said, "Giving them benefits in the past was 'kindness.' Now is the time to show 'power.'"
 
-　　“是的，”[萧子山][y001]解释着，他们既然现在还不能把这些“眼睛”挖掉，就只能把“眼睛”扭转过来。
+"Yes," [Xiao Zishan][y001] explained. Since they couldn't gouge out these "eyes" for now, they could only "turn the eyes" to their side.
 
-　　“这样就行了吗？”
+"Will this be enough?"
 
-　　“只是开始吧。忠心这种东西，光凭几句话是建立不起来的，收小弟很难啊。”
+"It's just the beginning. Loyalty is not something that can be built with just a few words. It's very difficult to recruit followers."
 
-　　获得忠诚，第一是有力量——没人会忠于一个软弱的个人或者组织；第二是要有利益，有了利益才会有奋发的动力。过去他们已经给了利益，下面就得表现自己的力量。到了一定程度，自然就水到渠成了。
+To gain loyalty, the first thing is to have strength—no one will be loyal to a weak individual or organization; the second is to have benefits. Only with benefits will there be the motivation to strive. In the past, they had given benefits. Now, they had to show their strength. When it reached a certain level, it would naturally fall into place.
 
-　　“我看穿越前辈们都很容易，几句话小弟们就倒头就拜了。”
+"I see that the transmigration predecessors all had it easy. With just a few words, their followers would bow down to them."
 
-　　“俺们没王八气吧？”
+"We don't have the protagonist aura, do we?"
 
-　　“你有好了，我可不想要……”
+"You can have it, I don't want it..."
 
-　　饭桌上的气氛又活跃起来，[萧子山][y001]暗暗舒了口气，其实这次谈话他也没有很大的把握，不过他利用了女人对往事的害怕心理。
+The atmosphere at the dinner table became lively again. [Xiao Zishan][y001] secretly breathed a sigh of relief. In fact, he was not very confident about this conversation, but he had taken advantage of the woman's fear of her past.
 
-　　说了片刻话，高弟来了，他人虽小却很机灵，见母亲眼睛红红的心知有事，赶紧带了账本过来参见。
+After a while of talking, Gao Di came. Although he was young, he was very clever. Seeing his mother's red eyes, he knew something was wrong and hurriedly brought the account book over to see them.
 
-　　[文德嗣][y002]随意问了问家中情况，又看了账本——这账本不过是流水账而已，宅子里的出入又简单，用不了多久就看得明白，便又夸奖几句，见他不安之色渐渐消退，才问：
+[Wen Desi][y002] casually asked about the family situation and looked at the account book—this account book was just a running account, and the income and expenditure of the residence were simple, so it didn't take long to understand. He then praised him a few more times. Seeing that his uneasiness was gradually dissipating, he then asked:
 
-　　“最近高家的人常来吗？”
+"Do people from the Gao family come often recently?"
 
-　　“常来！”男孩子倒毫不隐讳，用力点点头，“那个阎小帽经常来，每次都找爹嘀嘀咕咕的。”
+"They come often!" The boy did not hide it at all and nodded vigorously. "That Yan Xiaomao comes often, and every time he whispers with my father."
 
-　　“阎小帽？”[文德嗣][y002]一愣，才反应过来他说的是阎管事——他是经常戴一顶六合一统小帽。
+"Yan Xiaomao (Yan Small Hat)?" [Wen Desi][y002] was taken aback for a moment, then realized he was talking about Manager Yan—he often wore a six-in-one small hat.
 
-　　“都说些什么？”
+"What do they talk about?"
 
-　　高弟略一迟疑，[萧子山][y001]道：“你尽管说就是。”
+Gao Di hesitated for a moment. [Xiao Zishan][y001] said, "Just say whatever you want."
 
-　　“好像那阎小帽总是打听老爷们的消息，”高弟说，“不过爹不许我在身边听他们说话。”
+"It seems that Yan Xiaomao is always asking about the masters' news," Gao Di said. "But my father doesn't let me listen to them talk."
 
-　　“高家的人对你好么？”
+"Are the people of the Gao family good to you?"
 
-　　“好？”高弟对这个问题不大明白，“不知道好不好，我……没当过高家的差使，账房里几个先生待我还好，还有几个孩子，我们常一起玩。”
+"Good?" Gao Di didn't quite understand this question. "I don't know if they are good or not. I... have never served in the Gao family. The several masters in the accounting office are quite good to me, and there are a few other children. We often play together."
 
-　　“都是高家的奴仆么？”
+"Are they all slaves of the Gao family?"
 
-　　“是，有家生子，也有我这样的。”
+"Yes, some are born in the house, and some are like me."
 
-　　“那些孩子们里有和你特别好的人没有？”
+"Among those children, is there anyone you are particularly good with?"
 
-　　“有好些呢，小李、小钱、王家哥俩……”
+"There are quite a few. Little Li, Little Qian, the Wang brothers..."
 
-　　“好，一会你到书房来，开个名册。”[文德嗣][y002]吩咐道。
+"Good. Come to the study in a while and make a list of names," [Wen Desi][y002] instructed.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
