--- a/_posts/2009-9-26-1-02600.md
+++ b/_posts/2009-9-26-1-02600.md
@@ -1,159 +1,160 @@
 ---
 layout: post
-title: 第二十六节 羊城暗哨
+title: "Section 26: The Undercover Sentinels of Guangzhou"
 category: 1
 path: 2009-9-26-1-02600.md
 tag: [normal]
 ---
 
-　　从一开始执委会就把高家的两个孩子作为工作的重点。成年人的观念一旦形成就很难再改变。相形之下，少年儿童的思维活跃，对权威有着天然的蔑视心态，容易被新奇的东西所打动，他们又热爱冒险，急于证明自己有不输于成人的能力——这些都是穿越者可以利用的。
+From the very beginning, the Executive Committee had focused its work on the two children of the Gao family. Once an adult's mindset is formed, it is difficult to change. In contrast, the minds of teenagers and children are active, they have a natural contempt for authority, are easily moved by new things, they love adventure, and are eager to prove that they are no less capable than adults—all of which could be used by the transmigrators.
 
-　　每次穿越他们都花了很多时间与两个孩子相处，以观察他们的个性能力。相对于高露洁，作为男孩的高弟更有价值——女孩子的交际范围小，很少有机会出头露面。高弟的年龄更小，观念性格的可塑性比姐姐要大得多。
+Each time they crossed over, they spent a lot of time with the two children to observe their personalities and abilities. Compared to Gao Lujie, Gao Di, as a boy, was more valuable—girls had a small social circle and rarely had the opportunity to show their faces. Gao Di was younger, and his mindset and character were much more malleable than his sister's.
 
-　　高弟聪慧机敏，[萧子山][y001]教他些记账算术之法，都是一教就会，有时候[文德嗣][y002]特意叫他去做几件小事，也能办得妥帖。赏给一些现代的糖果零食总是会拿回去和姐姐共享，可见品性不贪不独，是个有责任感的人。
+Gao Di was intelligent and quick-witted. When [Xiao Zishan][y001] taught him some methods of bookkeeping and arithmetic, he learned them immediately. Sometimes [Wen Desi][y002] would specifically ask him to do a few small things, and he could also handle them properly. When given some modern candies and snacks as a reward, he would always take them back to share with his sister, which showed that his character was not greedy or selfish, and that he was a responsible person.
 
-　　进得书房来，却见这一对姐弟都直挺挺地跪在地上。北炜眉毛一挑，似乎是要发火，[文德嗣][y002]知道他见不得这些，忙止住了。
+When they entered the study, they saw the brother and sister kneeling straight on the ground. Bei Wei's eyebrows twitched, as if he was about to get angry. [Wen Desi][y002] knew he couldn't stand such things and quickly stopped him.
 
-　　“起来吧，平白无故地跪在这里做什么，当我们是城隍老爷么？”[文德嗣][y002]微微含笑抬手。
+"Get up. Why are you kneeling here for no reason? Do you think we are the city gods?" [Wen Desi][y002] raised his hand with a slight smile.
 
-　　“请老爷们恕奴才们母亲之罪。”两个孩子并不起来，齐齐地说着一起磕头。
+"We beg the masters to forgive our mother's crime." The two children did not get up, but said in unison and kowtowed together.
 
-　　“前面已说了，不知者不罪，”[文德嗣][y002]说，“你们都起来吧。”
+"I have already said before, the ignorant are not guilty," [Wen Desi][y002] said. "You both get up."
 
-　　“谢老爷恩典。”姐弟两人对视一眼，面露欣喜之色，忙站了起来。
+"Thank you for the master's grace." The brother and sister exchanged a glance, a look of joy on their faces, and quickly stood up.
 
-　　“高露洁你先出去，有话和高弟说。”
+"Gao Lujie, you go out first. I have something to say to Gao Di."
 
-　　“奴婢知道。”高露洁轻快的应着，退了出去。北炜站起身来，走到窗边，看到高露洁已经退了出去，这才点点头。
+"This servant knows." Gao Lujie responded cheerfully and withdrew. Bei Wei stood up, walked to the window, and saw that Gao Lujie had already left, only then did he nod.
 
-　　[萧子山][y001]问道：“对广州城熟吗？”
+[Xiao Zishan][y001] asked, "Are you familiar with Guangzhou city?"
 
-　　“熟，以前高宅里的人常差我去跑腿，去一次给几文钱。”
+"Familiar. People in the Gao residence used to often send me on errands. I got a few coins each time."
 
-　　“时才问你那些伙伴，现在还常在一起玩耍？”
+"The companions I asked you about just now, do you still often play together?"
 
-　　“有几个被挑了差，其他的都歇在家里没事做，常约我出去玩耍。”
+"A few have been chosen for jobs, the others are all idle at home with nothing to do. They often ask me to go out and play."
 
-　　“这里面有靠得住的人吗？”
+"Are there any reliable people among them?"
 
-　　高弟猛一抬头：“老爷要收家人？”
+Gao Di suddenly raised his head: "Does master want to recruit household servants?"
 
-　　果然是聪明的孩子，[萧子山][y001]暗暗点头。
+*A clever child indeed*, [Xiao Zishan][y001] thought, nodding to himself.
 
-　　“眼下还不需要，”他故意把话说得很活，“这和选家人不是一码事，不过也有些关系。”
+"Not at the moment," he deliberately said vaguely. "This is not the same as selecting household servants, but it is somewhat related."
 
-　　“那请老爷示下，要什么样的人。”
+"Then please instruct me, master, what kind of person are you looking for?"
 
-　　“要几个对广州城熟悉的孩子，每天把街面上的新闻和行情报来，”[萧子山][y001]根据事先讨论好的内容一一告诉他要哪些商品的行情。
+"I need a few children who are familiar with Guangzhou city to report the news and market prices on the streets every day," [Xiao Zishan][y001] told him one by one the market prices of the goods they wanted, based on what had been discussed beforehand.
 
-　　“这个容易，去各行的茶馆看水牌就知道。”
+"That's easy. You can find out by looking at the water boards at the teahouses of the various guilds."
 
-　　“每天把这些东西都汇总成册，按我教给你的记账法做好。”
+"Compile all these things into a ledger every day, and do it according to the bookkeeping method I taught you."
 
-　　“小的明白。”
+"I understand."
 
-　　“每月额外给你一两白银，作为活动费用。人由你选，可得好好的挑，不可靠的，爱乱说话的人一律不要。另外，高家的消息要时刻注意着些。”[萧子山][y001]紧紧地盯着他的眼睛，“有什么事情不要记，待我们来了说来听。”
+"I will give you an extra tael of silver every month as an activity fund. You choose the people, but you must choose well. Unreliable people and those who love to gossip are not wanted. In addition, keep a close eye on the news from the Gao family." [Xiao Zishan][y001] stared intently into his eyes. "If anything happens, don't write it down. Wait until we come and tell us."
 
-　　[萧子山][y001]说一句，高弟应一声，他看到这男孩子脸上有些惶恐，但是兴奋之情却溢于颜表。
+For every sentence [Xiao Zishan][y001] said, Gao Di would respond. He saw that the boy's face was a little frightened, but the excitement was overflowing.
 
-　　“你家在高宅可有友好的人？”
+"Does your family have any friendly people in the Gao residence?"
 
-　　“有，常叔叔，我爹的义弟。在外宅打杂的。”又七七八八地说了不少，这个高常是他爹的同乡，投进府六七年了。他力气大又有点武功本来可以挑家丁的，不过说话太直，又没钱孝敬管事，闹得上面都不待见，打杂打到二十五六了连个粗使丫头都配不到。
+"Yes, Uncle Chang, my father's sworn brother. He works as a general servant in the outer residence." He then went on to say a lot more. This Gao Chang was from his father's hometown and had sold himself to the Gao family six or seven years ago after fleeing a famine. He was strong and knew some martial arts, so he could have been chosen as a household guard, but he was too blunt, had no money to bribe the managers, and ended up being disliked by his superiors. He had been a general servant until he was twenty-five or six and couldn't even get a rough maid for a wife.
 
-　　“是光棍一条？”
+"He's a bachelor?"
 
-　　“对，不过常叔叔倒是很看得开，不大发牢骚。”
+"Yes, but Uncle Chang is quite open-minded and doesn't complain much."
 
-　　几个人互相看了一眼，这倒是个合适的发展对象：在原单位不得志的人会乐于跳槽，说话直是人耿直没心机，不爱发牢骚说明此人的心态平和，最后力气大又有武功也有用处。
+The few of them looked at each other. This was a suitable candidate for development: someone who was not appreciated in his original unit would be happy to jump ship. Being blunt meant he was straightforward and not scheming. Not complaining much showed that his mentality was peaceful. Finally, being strong and knowing martial arts was also useful.
 
-　　当然这话都是他的侄儿说得，未免有溢美的地方。不过现在是用人之际，不用抠得太细。再说人是否合适，也得用了才知道。
+Of course, these were all words from his nephew, so there might be some exaggeration. But now was a time when they needed people, so they didn't need to be too picky. Besides, whether a person was suitable or not could only be known after they were used.
 
-　　“要传常叔叔过来吗？他今天不当差值。”
+"Should I call Uncle Chang over? He is not on duty today."
 
-　　“好，你去请他。”
+"Alright, you go and invite him."
 
-　　“我就说爹爹请他喝酒，他自会来的。”
+"I'll just say that father is inviting him for a drink, and he will come."
 
-　　好高的悟性，不用吩咐保密，就心领神会了。不过这孩子如此的聪明，日后如果驾驭不好反而是祸害。[萧子山][y001]的想法一向比较阴暗。
+What high comprehension. Without being told to keep it a secret, he had already understood. However, this child was so clever that if he was not handled well in the future, he would be a disaster. [Xiao Zishan][y001]'s thoughts were always a bit dark.
 
-　　不多会高常来了，在高弟引见下过来磕头相见。打量他身材不高，体格颇健壮，行走举止间的动作颇为灵活。
+Before long, Gao Chang arrived. Under Gao Di's introduction, he came over to kowtow and greet them. They sized him up. He was not tall, but his physique was quite strong, and his movements were quite agile.
 
-　　[萧子山][y001]只问些身世背景和在高家的当差的事情。
+[Xiao Zishan][y001] only asked about his background and his work in the Gao family.
 
-　　“……在外宅当杂役六年了。”高常禀道。
+"...I have been a general servant in the outer residence for six years," Gao Chang reported.
 
-　　“我看你仪表堂堂，身手也还不错。怎么一直当杂役？”
+"I see that you have a dignified appearance and your skills are not bad. Why have you always been a general servant?"
 
-　　“小的生性笨拙，说不来话，故此一直当杂役。”
+"I am clumsy by nature and not good with words, so I have always been a general servant."
 
-　　“可曾娶妻？”
+"Have you ever married?"
 
-　　“没有……”高常脸红了，“太穷了，没女人肯跟我。”
+"No..." Gao Chang blushed. "I am too poor, no woman is willing to be with me."
 
-　　“你给他们家当差这些年，高家也不给你配个丫鬟？”
+"You have served their family for these years, and the Gao family hasn't even assigned you a maid?"
 
-　　“实在是小人太穷，配了女人怕也留不住。”
+"It is really that I am too poor. Even if I were assigned a woman, I'm afraid I couldn't keep her."
 
-　　[萧子山][y001]想这人不错，主家对他没什么恩典，他在外人面前也不说主家一句坏话。
+[Xiao Zishan][y001] thought, *this person is not bad*. His master had shown him no grace, yet he did not speak a single bad word about his master in front of outsiders.
 
-　　“高家待你如何？”
+"How does the Gao family treat you?"
 
-　　“小的一介奴仆，主家给衣穿给食吃，便是恩典了。”说话不卑不亢，进退自如。
+"I am just a servant. It is a grace for the master to give me clothes to wear and food to eat." He spoke neither humbly nor arrogantly, and his demeanor was natural.
 
-　　[萧子山][y001]看了一眼北炜，这个前侦察兵猛得跳起来，将用力一推，高常猝不及防，猛得后摔过去，连退了七八步才站住。虽然满脸诧异，却只敛了下衣服，继续垂手而立。
+[Xiao Zishan][y001] glanced at Bei Wei. The former reconnaissance soldier suddenly jumped up and gave him a hard push. Gao Chang was caught off guard and stumbled backward, taking seven or eight steps back before he could stand firm. Although his face was full of surprise, he just straightened his clothes and continued to stand with his hands down.
 
-　　北炜点了点头，这人的下盘很稳，果然是有功夫在身的。
+Bei Wei nodded. This person's stance was very stable. He really did have some kung fu.
 
-　　“你会武功？”[萧子山][y001]问。
+"You know martial arts?" [Xiao Zishan][y001] asked.
 
-　　“乡间的功夫，练了防身健体，叫老爷们见笑了。”
+"Just some country kung fu, practiced for self-defense and health. I have made a fool of myself in front of the masters."
 
-　　[萧子山][y001]点点头，不再多问什么，叫高弟送他出去吃酒。
+[Xiao Zishan][y001] nodded and asked no more questions, telling Gao Di to take him out for a drink.
 
-　　高弟退了出去，这次面试的结果是大家都比较满意，不过如何招罗这个人过来还得另外想办法。几个人就下面要在广州城内开展的工作进行了讨论。眼下他们已经发展了第一个情报网，这个情报网的作用并不在于收集什么情报，只是看看高弟作为这样一个角色是否堪用，同样也可以印证高家是否会忠诚。
+Gao Di withdrew. The result of this interview was that everyone was quite satisfied, but how to recruit this person over still required another plan. The few of them discussed the work to be carried out in Guangzhou city. For now, they had developed their first intelligence network. The purpose of this intelligence network was not to collect any intelligence, but to see if Gao Di was capable of such a role, and also to verify whether the Gao family would be loyal.
 
-　　如果高青执迷不悟的继续做高老爷的探子，那么下一步就得尽快重新寻找新人了。
+If Gao Qing stubbornly continued to be Master Gao's spy, then the next step would be to find new people as soon as possible.
 
-　　“我觉得高青对高老爷的态度也是暧昧的。”北炜说，“看他老婆孩子的样子，不大象死心塌地的模样。”
+"I think Gao Qing's attitude towards Master Gao is also ambiguous," Bei Wei said. "Looking at his wife and children, they don't seem to be completely devoted."
 
-　　“我赞成这样的说法。”[文德嗣][y002]点了点头，“高青不过是慑于高举的权势，实际上他对这个旧主没多少忠心。”
+"I agree with that statement," [Wen Desi][y002] nodded. "Gao Qing is merely intimidated by Gao Ju's power. In fact, he doesn't have much loyalty to his old master."
 
-　　“其实他更怕的是要跟随我们背井离乡，我们现在顶着个澳洲海商的头衔。他可不是来自出洋漂海习惯了的粤闽之地。”
+"Actually, what he fears more is having to leave his home and follow us. We now have the title of Australian sea merchants. He is not from Guangdong or Fujian, where people are used to going overseas."
 
-　　“我们先争取他老婆孩子，今天之后，他以后再去汇报之前就会好好想想了。”
+"We will first try to win over his wife and children. After today, he will think carefully before he goes to report again."
 
-　　“他还会去吗？”
+"Will he still go?"
 
-　　“我想还会的，只不过会少很多。高青胆小没主见，旧主的积威犹在，他还存着一条留后路的想法，不脱离高举的影响范围这个人就没法信用。”
+"I think he still will, but much less often. Gao Qing is timid and has no backbone. The old master's authority is still there, and he still wants to keep a way out. This person cannot be trusted until he is out of Gao Ju's sphere of influence."
 
-　　“我们要尽快有自己的宅子。”
+"We need to have our own residence as soon as possible."
 
-　　“对，眼下我们图的是贸易方便，但是在最后一次穿越之前，一定要搞到新的宅子。”
+"Right. For now, we are looking for convenience in trade, but before the final transmigration, we must get a new residence."
 
-　　“高弟倒是不错，可惜是个孩子。买宅第、奴仆这样的事情都做不了。”
+"Gao Di is not bad, but it's a pity he's a child. He can't do things like buying a residence and servants."
 
-　　“高常呢……”
+"What about Gao Chang..."
 
-　　“有人！”北炜忽然喊了一声，闪到了窗边，随手捏起盆景里的一块石头飞了出去。外面一声闷响。似乎打中了什么。
+"Someone's here!" Bei Wei suddenly shouted, flashing to the window. He casually picked up a rock from a potted plant and threw it out. There was a muffled thud outside. It seemed to have hit something.
 
-　　三个城市宅男一时都慌了神，瘫倒在椅子上大气都不敢出。
+The three urban nerds were all flustered for a moment, collapsing in their chairs, not daring to breathe.
 
-　　“怎么回事？”[文德嗣][y002]战战兢兢的问。
+"What happened?" [Wen Desi][y002] asked tremblingly.
 
-　　“对面院角有个黑影晃过去了。”北炜忿忿然“天还没黑就来潜入侦察，好大的胆子。”
+"A black shadow flashed past the corner of the courtyard opposite," Bei Wei said resentfully. "To come and spy before it's even dark, what audacity."
 
-　　“偷听的？”
+"An eavesdropper?"
 
-　　“应该是。”北炜说，“路线是曲折向窗下来的。”
+"Should be," Bei Wei said. "The route was winding towards the window."
 
-　　“是高举的人？”
+"Is it Gao Ju's man?"
 
-　　“不像，高举在这里已经有耳目。我们和他的生意做得这么顺，他根本没必要再来做这种会触怒我们的事情。”
+"Doesn't seem like it. Gao Ju already has eyes and ears here. Our business with him is going so smoothly, there's no need for him to do something like this that would anger us."
 
-　　“那会是谁？”
+"Then who could it be?"
 
-　　“恐怕是那些眼红他的人吧。”[萧子山][y001]想到送给他们宅子的时候高举说的话：“只是最近这些奇货上市，我这里颇受人关注”。这应该就是那些“关注”的人了。
+"I'm afraid it's those who are jealous of him," [Xiao Zishan][y001] thought of what Gao Ju had said when he gave them the residence: "It's just that recently, with these strange goods on the market, my place has attracted a lot of attention." This should be those who were "paying attention."
 
-　　事情，倒越发错综复杂起来。联想到今天高举心神不宁的样子，他们的思绪都有些紧张。
+Things were becoming more and more complicated. Thinking of Gao Ju's uneasy look today, their thoughts were all a little tense.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
