--- a/_posts/2009-9-28-1-02800.md
+++ b/_posts/2009-9-28-1-02800.md
@@ -1,99 +1,99 @@
 ---
 layout: post
-title: 第二十八节 黄雀会
+title: "Section 28: The Oriole Society"
 category: 1
 path: 2009-9-28-1-02800.md
 tag: [normal]
 ---
 
-　　广州的南城面临珠江，是海商洋舶停靠之地。宋代南城已成商业中心，有东西雁翅城保护。元代毁于兵乱。入明以后这里商业繁荣，但经拓林兵变，城南居民受害，官府即依雁翅城旧址筑新城。《广东通志》谓：“嘉靖四十二年甲子都御史吴桂芳以拓林兵变，躁践城外居民，创筑自西南角楼，以及五羊驿，环绕至东南角楼新城，以因防御。”
+The southern city of Guangzhou faces the Pearl River and is a place where sea merchants and foreign ships dock. In the Song Dynasty, the southern city had already become a commercial center, protected by the east and west Yanchi (Goose Wing) cities. It was destroyed by war in the Yuan Dynasty. After entering the Ming Dynasty, commerce here flourished, but after the Tuolin army mutiny, the residents outside the city suffered, and the government built a new city on the old site of the Yanchi cities. The "Guangdong Tongzhi" states: "In the 42nd year of Jiajing, the year of Jiazi, the Censor-in-Chief Wu Guifang, due to the Tuolin army mutiny and the trampling of the residents outside the city, initiated the construction of a new city from the southwest corner tower to the Wuyang post station, circling around to the southeast corner tower, for the purpose of defense."
 
-　　有了城墙的保护，新南城虽然面临珠江，三面临濠，在广州府三城之中面积最小，但洋舶区、码头区、商业区、富人住宅区均集中于此，成为了广州市商业经济中心地。
+With the protection of the city walls, the new southern city, although facing the Pearl River and surrounded by moats on three sides, was the smallest in area among the three cities of Guangzhou Prefecture. But the foreign ship area, the wharf area, the commercial area, and the wealthy residential area were all concentrated here, making it the commercial and economic center of Guangzhou.
 
-　　此时南城的靖海门外的珠江堤岸上，站着几个人，身披蓑衣，头戴笠帽。似乎在巡视着什么。
+At this time, on the bank of the Pearl River outside the Jinghai Gate of the southern city, stood several people, wearing straw raincoats and bamboo hats, seemingly on patrol.
 
-　　阴霾紧凑，烟雨朦胧。江面上隐隐约约停泊着十来艘帆船，水雾浓处只见着黑簇簇的轮廓。远眺拾翠洲，白鹅潭，藏匿在烟波深密处，仿佛与云天连接一片。
+The sky was overcast, and a misty rain was falling. On the river, a dozen or so sailboats were faintly visible, their silhouettes dark and clustered in the thick water mist. Looking into the distance at Shicui Island and the White Goose Pond, they were hidden in the dense mist and waves, as if connected to the clouds and sky.
 
-　　“操蛋，哪来的澳洲海船。”内中一个人吐了口唾沫，愤愤道。
+"Damn it, where did these Australian sea ships come from?" one of them spat and said resentfully.
 
-　　“王头儿，我们都找了十来天了，这沿江的各式海船也都看了个遍，哪有什么古怪的大船。”
+"Boss Wang, we've been searching for ten days now, and we've looked at all the various sea ships along the river, but there's no strange big ship."
 
-　　那被唤作王头儿的人并不答话，望了半日，默默无语。江中心涟沦圈圈，老鱼吹浪。岸堤下怪石嶙峋，浊浪击拍。离他们不远处一条洋船正在卸货，一群脚夫肩着货物从船舷边下来码头趸库。
+The man called Boss Wang did not answer, but stared for a long time in silence. In the center of the river, ripples circled, and old fish blew waves. Under the riverbank were rugged rocks, against which the turbid waves crashed. Not far from them, a foreign ship was unloading cargo. A group of porters carried goods on their shoulders from the side of the ship to the warehouse on the wharf.
 
-　　“王大哥，我真不明白。老爷在中左所好好的，怎得又发了兴头要我们来寻什么澳洲海商？我跟随老爷这些年，东洋西洋都走过，何曾听过劳什子的澳洲！”
+"Big Brother Wang, I really don't understand. The master is doing well in the Central-Left Guard, why did he suddenly get the idea to send us to find some Australian sea merchants? I have followed the master for these years, and have traveled to the East and West Seas, but I have never heard of any damn Australia!"
 
-　　那王头儿冷哼了一声，斥道：“你们瞎掰个什么，这里是什么地方？！脑袋不要了？”
+That Boss Wang snorted coldly and rebuked, "What are you blabbering about? What place is this?! Don't you want your head anymore?"
 
-　　众人听了，都默然了。
+Hearing this, everyone fell silent.
 
-　　半晌，才听得王头儿说道：“澳洲虽是我等从未停说过的地方，但是那濠畔街上高家的铺子里卖得东西总不是天上掉下来的吧？广州城眼下举城若狂，谁不知晓澳洲的奇货。这等发财的买卖，既然从海上过得，我等兄弟怎能不好好的生发一笔。”他狞笑起来，“这次一定要探出这伙海商的底细来。”
+After a long while, Boss Wang was heard to say: "Although Australia is a place we have never heard of, the things sold in the Gao family's shop on Haopan Street didn't just fall from the sky, did they? The whole city of Guangzhou is in a frenzy right now. Who doesn't know about the strange goods from Australia? Since this kind of profitable business passes through the sea, how can we brothers not make a good fortune from it?" He grinned sinisterly. "This time, we must find out the background of this group of sea merchants."
 
-　　原来这些人，乃是眼下寇略福建，震动闽粤二省的“巨寇”郑芝龙的部下。眼下他伙同李魁奇，聚众三万余人，占据着闽南的中左、鼓浪屿、大担、烈屿、高蒲等一系列沿海重要岛屿和海口，或寇掠商船，勒人报水，或突入内地，烧杀掳掠，已然成闽南沿海海面的一霸。
+It turned out that these people were the subordinates of the "great pirate" Zheng Zhilong, who was currently plundering Fujian and shaking the two provinces of Fujian and Guangdong. At this moment, he, along with Li Kuiqi, had gathered a force of more than thirty thousand men and occupied a series of important coastal islands and ports in southern Fujian, such as Zhongzuo, Gulangyu, Dadan, Lieyu, and Gaopu. They either plundered merchant ships and extorted protection money, or made sudden raids into the mainland, burning, killing, and looting, and had already become a hegemon on the seas of the southern Fujian coast.
 
-　　一行人沿码头边向城内走去，渐渐见行人货贩增多。过了龙王庙，便看见的靖海门城楼了。进得城来，沿着路一直往五羊门去，前面巍峨壮丽的一座大庙观，是洪武年间建的天妃庙了。这里是南城的交通中心，五方杂处之地，各色人等夹杂着轿子骡车熙来攘往，商贩荟集，市场热闹，只见人声嘈杂，货摊连绵，一片买卖兴盛的市面。
+The group walked along the wharf towards the city. Gradually, they saw more pedestrians and vendors. After passing the Dragon King Temple, they saw the Jinghai Gate tower. Entering the city, they walked along the road towards the Wuyang Gate. In front of them was a magnificent great temple, the Tianfei Temple built in the Hongwu reign. This was the transportation center of the southern city, a place where people from all five directions gathered. All sorts of people, mixed with sedan chairs and mule carts, bustled back and forth. Merchants gathered, and the market was lively. There was a clamor of voices, and endless rows of stalls, a scene of prosperous trade.
 
-　　这王头儿显见十分的小心，只沿着墙根走，拐过弯，行到巷子里去，城根便有一家小酒店。挂着油黑乌糟的半挂竹帘。一众人踅进店堂。店堂间悬着几盏油灯，即是白天也十分昏暗。吃客们闹哄哄一片，地上湿吱吱，滑漉漉，弥漫着菜香酒香油烟汗臭混杂的怪味。
+This Boss Wang was obviously very cautious. He only walked along the base of the wall, turned a corner, and went into an alley. At the base of the city wall was a small tavern, with a greasy and dirty half-drawn bamboo curtain hanging. The group slipped into the tavern. A few oil lamps hung in the tavern, and it was very dim even during the day. The customers were in a noisy uproar. The floor was wet and slippery, filled with a strange smell mixed with the aroma of food, wine, oily smoke, and sweat.
 
-　　企堂见有人进来，忙上来招呼客人。王头儿要了一间单间空座，叫了些许酒菜。帘子并不完全放下，拴起一半来，坐在门口的兄弟便能纵观全店。
+The waiter saw someone come in and hurried over to greet the customers. Boss Wang asked for a private room, and ordered some wine and dishes. The curtain was not completely lowered, but was tied up halfway, so that the brothers sitting at the door could have a full view of the whole tavern.
 
-　　等了片刻，店门口又走进个街面上游手混混般的人物，是个面白无须的中年人。双方眼神相遇，新来的人便自进来落座，也不寒暄，一众人只自顾自的吃喝起来。那王头儿见店内并无便衣的快手番子，才悄声问道：“濠畔街上的兄弟有什么消息？”
+After waiting for a moment, another figure who looked like a street loafer walked in through the tavern door. He was a fair-faced, beardless middle-aged man. Their eyes met, and the newcomer came in and sat down without any pleasantries. The group just ate and drank on their own. Seeing that there were no plainclothes constables in the tavern, Boss Wang then asked in a low voice, "Is there any news from the brothers on Haopan Street?"
 
-　　“盯梢快半个月，没什么有用的。只见那高府里的货色一担一担的挑运出来，送到铺子里，就是没见有特别的货物进去过，也不曾见到什么古怪人物。”
+"We've been tailing them for almost half a month, but there's nothing useful. We've only seen goods being carried out of the Gao residence in one load after another and sent to the shops, but we've never seen any special goods go in, nor have we seen any strange people."
 
-　　“真是见鬼了！”这王头无心吃菜，盯着一盘热腾腾香喷喷的葱爆蛇丝，“这么多货物怎么进去的？”莫非是障眼法？这澳洲的货物不是从高家运出来的，只不过用这个手段来掩饰？
+"Damn it!" This Boss Wang had no appetite for food, staring at a plate of hot and fragrant stir-fried snake with scallions. "How did so much cargo get in?" Could it be a diversion? Were the Australian goods not transported from the Gao family, but this was just a means to cover it up?
 
-　　“高家在码头上的栈房呢？”
+"What about the Gao family's warehouse at the wharf?"
 
-　　“也打听过了，”他摇了摇头，“高家铺子里规矩很严，根本打探不出什么东西。兄弟们打听了多日才知道栈房的管事有个相好是半掩门，花了些银子才从那女人嘴里打听到点消息。”说着便住了口，自顾自的喝起酒来。
+"We've asked about that too," he shook his head. "The rules in the Gao family's shop are very strict, and we can't find out anything. The brothers asked around for many days and only found out that the manager of the warehouse has a lover who is a prostitute. It took some silver to get some news from that woman." He then stopped talking and drank his wine on his own.
 
-　　王头知道这个地面上的社鼠又在借机讹钱，心里骂了一句，只说：“银子好说，打听到了什么？”
+Boss Wang knew that this local rat was taking the opportunity to extort money again. He cursed in his heart, but only said, "The silver is not a problem. What did you find out?"
 
-　　“管事的说，澳洲货从来不在栈房收发，全部从高举的本宅私栈内发出来。每次发出也不多，只有几箱货色。不过件件都价值不菲的东西。”那中年汉子说着，眼光里流露出贪婪之色。
+"The manager said that the Australian goods are never received or dispatched at the warehouse. They are all dispatched from Gao Ju's private warehouse in his main residence. Each time, not much is dispatched, only a few boxes of goods. But each item is worth a lot of money." As the middle-aged man spoke, a greedy look appeared in his eyes.
 
-　　“多久发一次货？”
+"How often are the goods dispatched?"
 
-　　“没个准，一般总在十天上下。”
+"There's no fixed time, but it's usually around every ten days."
 
-　　这说明货物的确是从高宅里出来的，但是怎么进去的呢？高家又不是大海边，船是开不进去的。难道从天上掉下来？
+This showed that the goods did indeed come from the Gao residence, but how did they get in? The Gao family was not by the sea, and ships could not sail in. Did they fall from the sky?
 
-　　“高家运进府的东西，可探查过？”
+"Have you investigated the goods transported into the Gao residence?"
 
-　　“这事情请了脚行的飞脚老三帮忙，他可要了不少钱……”
+"For this matter, we asked Feijiao Laosan from the porters' guild for help. He asked for a lot of money..."
 
-　　“好说。”王头儿嘴上这么说，却摸了下袖子里的短刀。
+"No problem," Boss Wang said, but he touched the short knife in his sleeve.
 
-　　“他可要了十两银子，”中年汉子眯起眼睛看着王头儿，试探他的反应。王头一脸呆笑，并不答话，扫过周边几个人，都在冷笑。这汉子忽然想起了面前坐得是谁的人，赶紧接了下去，“飞脚老三吩咐人偷偷查验过高家运进的东西，的确有古怪！”
+"He asked for ten taels of silver," the middle-aged man squinted at Boss Wang, testing his reaction. Boss Wang had a blank smile on his face and did not answer, but glanced at the few people around him, who were all sneering. The man suddenly remembered who the people sitting in front of him were and quickly continued, "Feijiao Laosan ordered his men to secretly inspect the goods transported into the Gao family, and indeed there was something strange!"
 
-　　“哦？货色是夹带进去的？”
+"Oh? Were the goods smuggled in?"
 
-　　“不是不是，而是运进运出的东西有点古怪。”
+"No, no, it's that the goods transported in and out are a bit strange."
 
-　　他们买通了脚行的上下，私下察看了一个月来高宅运进运出的大宗货物，运进去的东西，过去都是以瓷器、铁器之类为主，运出来也大致相同。可这个月就不同了，除了这些，又运进了许多麝香、龙诞香、紫檀这样的进去——最奇怪的是从来没运出来过，仿佛一进去便石沉大海了。
+They had bribed the porters' guild and secretly inspected the bulk goods transported in and out of the Gao residence for a month. In the past, the goods transported in were mainly porcelain, ironware, and the like, and the goods transported out were roughly the same. But this month was different. In addition to these, a lot of musk, ambergris, and sandalwood were also transported in—the strangest thing was that they were never transported out, as if they had vanished into thin air once they went in.
 
-　　查了半天，还是没查明白到底是哪里来的。王头儿失望地叹了口气。以这些地面上城狐社鼠尚且打听不到什么东西，靠自己恐怕就更难查清了。
+After investigating for a long time, they still hadn't figured out where they came from. Boss Wang sighed in disappointment. If even these local city foxes and den rats couldn't find out anything, it would probably be even harder for him to find out on his own.
 
-　　掏出十几块洋钱，打发了他。一行人都觉得难以置信。他们潜入广州城一个月来，费了无数周折，打听到现在，虽然知道这些海商大致落脚在那里，但是他们的船停泊在何处，货物如何运来，依然一无所知。眼下，也只有等几天前派出准备潜入高家去的人的回报了。
+He took out a dozen or so silver dollars and sent him away. The group all found it hard to believe. They had been sneaking around Guangzhou for a month, going through countless troubles, and had found out so far that although they knew roughly where these sea merchants were staying, they still knew nothing about where their ships were docked or how their goods were transported. For now, they could only wait for the report from the men sent to infiltrate the Gao family a few days ago.
 
-　　等了许久，昨天准备潜入高宅的两个人才回来，其中一个脸上擦青了一道。王头看其神气变幻不定，知道事情不妙。
+After waiting for a long time, the two men who were supposed to infiltrate the Gao residence yesterday finally came back, one with a bruise on his face. Seeing his expression change uncertainly, Boss Wang knew that things were not good.
 
-　　“那边的后街都有栅，不便进去。我等就上了城墙绕了个圈子过去，在上面潜伏了几天才发现蹊跷的。”这二个人在过去前都是道上有名的飞贼大盗，因为犯了人命官司，被海捕缉拿才去投靠海寇，这次要带他们来广州涉险，郑家是许了重金的。
+"The back street over there has a fence, so it's not convenient to get in. We went up on the city wall and circled around, and after hiding there for a few days, we finally discovered something strange." These two men were famous thieves on the streets before. Because they had committed murder, they were wanted by the authorities and had to seek refuge with the sea pirates. This time, to bring them to Guangzhou for this risky venture, the Zheng family had promised a large sum of money.
 
-　　他们在城墙上观察到了高宅后门出入的人和货担，发现都是从另外一家的后院出来的。便设法进到院子里察看了一番，看到了澳洲海商。
+They had observed the people and cargo going in and out of the back gate of the Gao residence from the city wall and found that they were all coming from the backyard of another house. So they found a way to get into that yard to have a look and saw the Australian sea merchants.
 
-　　“一共四个人，都穿着本朝的衣冠，可是髡发，象和尚。”
+"There were four of them in total, all wearing the clothes of this dynasty, but with shorn hair, like monks."
 
-　　知道这个院子有蹊跷，又察看了二天，发现这原是高家的秘宅，如今做了澳洲海商行馆。所有货物都是从这秘宅里搬运到高家去的，高家也搬运货物到秘宅里。
+Knowing that there was something strange about this courtyard, they observed it for another two days and found that it was originally a secret residence of the Gao family, and was now being used as a guesthouse for the Australian sea merchants. All the goods were transported from this secret residence to the Gao family, and the Gao family also transported goods to the secret residence.
 
-　　于是问题又绕了回来，还是没发现这群海商的货物是哪里运来的。
+So the problem came back to the beginning. They still hadn't found out where this group of sea merchants' goods came from.
 
-　　“本来还想听听他们的说话，可惜！”脸上有瘀青的狠狠道，“内中有练家子，刚想靠近就给他发现了，丢出石头来又快又狠。”
+"I originally wanted to listen to their conversation, but what a pity!" the one with the bruise on his face said fiercely. "There's a martial artist among them. As soon as I tried to get close, he discovered me and threw a rock, fast and hard."
 
-　　“我看，我们一不做二不休。”内中有人低声道，“干脆来个‘掏被窝’。把高家的阎管事或者干脆就把高举本人抓出来，还不都问个一清二楚！”
+"I say, let's just go all the way," someone said in a low voice. "Let's just 'scoop them out of their nest.' We'll grab the Gao family's Manager Yan, or even Gao Ju himself. Won't we be able to ask everything clearly then!"
 
-　　王头哼了一声：“抓出来？这濠畔街上的商户哪个是好惹的？不说他们手眼通天，就是府里养得护院家丁，也够你喝一壶的。”
+Boss Wang snorted: "Grab them? Which of the merchants on Haopan Street is easy to mess with? Not to mention their connections reaching to the heavens, just the household guards they keep are enough to give you a hard time."
 
-　　“那把海商抓一个出来。”那人嘿嘿笑着，“就算我们不惹高家，惹这几个没根底的海商还不是问题吧？听何大哥说，这里面也就一个练家子，又没高家的护卫。他就算满身是铁，能打几根钉？我们多召集几个身手好的弟兄，进去绑出一个来，带上船去，别说澳洲来的，就算是昆仑山上来的也得说个明白。再说，”他贪心地笑了起来，“要放人，还不得拿点好东西出来？”
+"Then let's grab one of the sea merchants," that person chuckled. "Even if we don't mess with the Gao family, it shouldn't be a problem to mess with these rootless sea merchants, right? I heard from Big Brother He that there's only one martial artist among them, and they don't have the Gao family's guards. Even if he's made of iron, how many nails can he make? We'll gather a few more brothers with good skills, go in and tie one up, take him to the ship. Not to mention coming from Australia, even if he came from Mount Kunlun, he'd have to talk. Besides," he laughed greedily, "if we want to let him go, won't he have to give us some good things?"
 
-　　众人一听轰然叫好。都看着王头。王头想这倒不失为一个办法。绑个海商不是什么大事，高举也不见得为此勃然大怒，日后还能留个余步。
+Everyone roared in approval at this. They all looked at Boss Wang. Boss Wang thought this was not a bad idea. Kidnapping a sea merchant was not a big deal. Gao Ju would not necessarily be furious about it, and they could still leave some room for maneuver in the future.
 
-　　想到这，几个人埋头谋划起来。
+At this thought, the few of them put their heads together and began to plot.
