--- a/_posts/2009-9-29-1-02900.md
+++ b/_posts/2009-9-29-1-02900.md
@@ -1,142 +1,143 @@
 ---
 layout: post
-title: 第二十九节 消失的文总
+title: "Section 29: The Disappearance of Chief Wen"
 category: 1
 path: 2009-9-29-1-02900.md
 tag: [normal]
 ---
 
-　　“头好昏……”[萧子山][y001]从梦中醒来，觉得昏沉沉的十分难受。最近几天他都睡得很好，明代的广州不仅空气清新，又没有一大早的汽车轰鸣之声。睡觉竟十分酣甜。
+"My head is so dizzy..." [Xiao Zishan][y001] woke from his dream, feeling groggy and extremely uncomfortable. He had been sleeping very well for the past few days. Not only was the air in Ming Dynasty Guangzhou fresh, but there was also no roar of cars early in the morning. His sleep had been exceptionally sweet.
 
-　　早先穿越贸易的时候，大家都不敢在明代时空过夜，入夜之前必然离开，宁可隔日再来。眼下随着他们的生意和人脉越来越巩固，在明代时空要做的事情也日益增多。为了延长虫洞的寿命，穿越之后住上几天已经是家常便饭。更何况这几天还可以过饭来张口，衣来伸手的腐朽生活，竟有点乐不思蜀的意思了。
+In the early days of the transmigration trade, everyone dared not spend the night in the Ming Dynasty time-space. They would inevitably leave before nightfall, preferring to come back the next day. Now, as their business and connections became more and more consolidated, the things they had to do in the Ming Dynasty time-space also increased day by day. In order to extend the life of the wormhole, it had become commonplace to stay for a few days after crossing over. What's more, these past few days they could live a decadent life of having food served to them and clothes put on for them, and they were beginning to feel a bit like they didn't want to go back.
 
-　　今天的头却十分沉重，勉强张开眼睛，雨过天晴的纱窗外已经是艳阳高照。看样子都快十点了。他不由感到奇怪，这个时空没有电视和网络，即使大家一起议事聊天，也都很早就入睡，所以每天早晨至晚七点也就醒了。今天怎么这么晚？
+But today, his head was very heavy. He forced his eyes open. Outside the gauze window, the sky was bright after the rain. It looked like it was almost ten o'clock. He couldn't help but feel strange. There was no TV or internet in this time and space. Even when everyone discussed matters and chatted together, they all went to bed very early, so they would wake up by seven in the morning at the latest. Why was it so late today?
 
-　　竖起身子扫视了一眼房间，大吃一惊。屋子里乱糟糟的一片狼藉，几乎所有的抽屉柜子都被打开了，东西乱掷了一地。
+He sat up and glanced around the room, and was greatly shocked. The room was in a mess, a complete shambles. Almost all the drawers and cabinets had been opened, and things were thrown all over the floor.
 
-　　遭贼了！
+We've been robbed!
 
-　　他的脑海里立刻反应出这个念头，不由得忧心如焚，这次贸易换到的钱和货，还堆在屋子里！要是……他简直不敢想像下去。赶紧起来穿衣着鞋——忽然发现自己的袜子和旅游鞋都不见了！真是遭贼了！屋里有几双草编的便履，赶紧套上脚，披着衣服出来。
+This thought immediately flashed through his mind, and he couldn't help but feel anxious. The money and goods from this trade were still piled up in the room! If... he simply dared not imagine it. He quickly got up to get dressed—and suddenly found that his socks and sneakers were gone! They had really been robbed! There were a few pairs of straw sandals in the room. He quickly put them on and came out with his clothes draped over him.
 
-　　刚一出门，就看到北炜从屋子里冲了出来，[萧子山][y001]注意到他的脚上也是一双便履，他的作战靴也不见了！
+As soon as he went out, he saw Bei Wei rushing out of his room. [Xiao Zishan][y001] noticed that he was also wearing a pair of sandals. His combat boots were also gone!
 
-　　“出事了！”北炜这话倒是简明扼要。
+"Something has happened!" Bei Wei's words were concise and to the point.
 
-　　“什么事情？”
+"What happened?"
 
-　　“[文总][y002]不见了！”
+"[Chief Wen][y002] is missing!"
 
-　　“什么！”这下可吓得[萧子山][y001]手足冰凉。[文总][y002]不见了！这可不是21世纪的广州：[文总][y002]跑出去到处认得人，还有全国最安全城市的警察——17世纪的广州，出了门他们一个人都不认得。连路怎么走都不知道。
+"What!" This scared [Xiao Zishan][y001] so much his hands and feet turned cold. [Chief Wen][y002] was missing! This was not 21st-century Guangzhou, where [Chief Wen][y002] could run out and know people everywhere, and there were the police of the safest city in the country—in 17th-century Guangzhou, they didn't know a single person outside the door. They didn't even know the way.
 
-　　两个人一路狂奔一间一间的察看，[王工][y003]还睡得死死的，再到第三进院子里的下房，高青一家和孙常也都睡得沉沉的。赶紧把大家都叫起来，都还晕头转向，恶心欲吐。高露洁和高弟姐弟却连喊带叫都不醒，正手足无措间，孙常出主意叫用冷水洗脸。
+The two of them ran wildly, checking room by room. [Engineer Wang][y003] was still sound asleep. Then they went to the servants' quarters in the third courtyard. The Gao family and Sun Chang were also in a deep sleep. They quickly woke everyone up. They were all still dizzy and nauseous. The siblings Gao Lujie and Gao Di wouldn't wake up even when shouted at. Just as they were at a loss, Sun Chang suggested washing their faces with cold water.
 
-　　“萧老爷，事情不好啊。”孙常看着高青一家手忙脚乱的给大家打水。一个个才稍觉得清醒了些。
+"Master Xiao, this is not good," Sun Chang said as he watched the Gao family busily fetching water for everyone. Only then did everyone feel a little more awake.
 
-　　“什么？！”
+"What?!"
 
-　　“这样子明显是中了迷香了。”
+"This is clearly a case of being hit with knockout incense."
 
-　　“迷香？”不知怎么的[萧子山][y001]脑海中转过的第一个词是孙二娘。
+"Knockout incense?" For some reason, the first name that came to [Xiao Zishan][y001]'s mind was Sun Erniang.
 
-　　“是迷香。”孙常从家乡逃荒出来，一路乞讨到的广州，见识了不少江湖上的事情，“老爷们可有东西失落？”
+"It is knockout incense." Sun Chang had fled from his hometown during a famine and had begged his way to Guangzhou, so he had seen a lot of things in the jianghu. "Have the masters lost anything?"
 
-　　这话提醒了他们，两人发足狂奔，到中院的西厢里。因为这房子是作为重要库房和穿越点使用的，执委会在这里做了一些非本时空的改装，用砖头砌没了窗口和多余的门扇不说，在里面用缠绕着刺铁丝的钢栅栏和防盗门单独做出了一间四面设防的小屋子。[萧子山][y001]见外面的木门挂锁已经不翼而飞，心知不妙，赶紧推门进去，铁栅和防盗门都安然无恙，满满一车的货物也都堆得好好的。这才松了口气。
+This reminded them. The two of them ran at full speed to the west wing of the middle courtyard. Because this house was used as an important warehouse and crossing point, the Executive Committee had made some non-contemporary modifications here. Not only had they bricked up the windows and extra doors, but they had also used steel bars wrapped with barbed wire and a security door to create a small, four-sided fortified room inside. [Xiao Zishan][y001] saw that the padlock on the outer wooden door was gone and knew something was wrong. He quickly pushed the door open. The iron grate and the security door were both intact, and the full cart of goods was also neatly stacked. Only then did he breathe a sigh of relief.
 
-　　看来贼人们没得手。这21世纪的防盗措施还是有效果的。问题是他们把[文总][y002]给丢了！这事比丢了货和金银更可怕。钱，总能赚回来，这么个大活人丢在明朝可就难说了。
+It seemed the thieves had not succeeded. The security measures of the 21st century were still effective. The problem was that they had lost [Chief Wen][y002]! This was more terrible than losing the goods and gold and silver. Money could always be earned back, but for such a living person to be lost in the Ming Dynasty, it was hard to say.
 
-　　“谁把[文总][y002]抓走了呢？”[萧子山][y001]的脑子风车般的运转，这到底是偶然事件还是蓄谋事件？很难说。说是蓄谋，知道他们在这里的，只有高家的人，除此之外他们和整个广州城没有其他的接触，高家的人绑架[文总][y002]有何意义？如果是偶然事件，难道是什么大盗进屋谋财不成，干脆绑了[文总][y002]的票？这也有可能。
+"Who kidnapped [Chief Wen][y002]?" [Xiao Zishan][y001]'s mind was spinning like a windmill. Was this an accidental event or a premeditated one? It was hard to say. If it was premeditated, the only people who knew they were here were the Gao family. Besides them, they had no other contact with the entire city of Guangzhou. What was the point of the Gao family kidnapping [Chief Wen][y002]? If it was an accidental event, could it be that some great thief had entered the house to steal, and failing that, simply kidnapped [Chief Wen][y002] for ransom? That was also possible.
 
-　　三人在[文总][y002]的房间转了半天，什么也没看出来，[文总][y002]的衣物鞋帽都不见了，连他每次穿越必带的防刺背心、防狼喷剂、电击器也都不翼而飞。
+The three of them circled around [Chief Wen][y002]'s room for a long time, but couldn't see anything. [Chief Wen][y002]'s clothes, shoes, and hat were all gone, and even the anti-stab vest, pepper spray, and stun gun he always carried with him when he crossed over were also gone.
 
-　　看了半天，[萧子山][y001]忍不住说了起来：
+After looking for a long time, [Xiao Zishan][y001] couldn't help but say:
 
-　　“老北，看出什么来了没有？你不是侦察兵吗？”
+"Old Bei, have you seen anything? Aren't you a reconnaissance soldier?"
 
-　　北炜把手一摊：“我是侦察兵，可不是侦察员啊，这得搞刑侦的人来看。”
+Bei Wei spread his hands: "I'm a reconnaissance soldier, not a criminal investigator. This needs someone from criminal investigation to look at."
 
-　　“我们找一个搞刑侦的过来好了。冉耀曾经干过警察。”[萧子山][y001]想了起来。
+"Let's find someone from criminal investigation to come over. Ran Yao used to be a policeman," [Xiao Zishan][y001] remembered.
 
-　　“那就赶快找他，还有那些喜欢在推理区混得推理狂人们多带几个过来。”[王工][y003]看到高纤正准备进来收拾屋子，马上喊道：“不要动，保护现场！”吓得高纤赶紧跑开了。
+"Then let's find him quickly, and also bring a few more of those mystery buffs who like to hang out in the reasoning section," [Engineer Wang][y003] said. Seeing that Gao Xian was about to come in to tidy up the room, he immediately shouted, "Don't move, preserve the scene!" which scared Gao Xian into running away.
 
-　　商量下来，由[王工][y003]先带着货物钱财穿回去，向执委会通报此事，再召集几个专业人员过来察看痕迹，[萧子山][y001]和北炜继续留在这里探查。
+After some discussion, it was decided that [Engineer Wang][y003] would first take the goods and money back through the wormhole to report the matter to the Executive Committee, and then summon a few professionals to come over and examine the traces. [Xiao Zishan][y001] and Bei Wei would continue to stay here to investigate.
 
-　　[萧子山][y001]把高青一家和孙常都喊来，盘问这些日子有无发生过什么特殊的事情，包括高宅的。问了半天，只从孙常嘴里知道：最近北京有位“小杨公公”要来拜访高老爷，高老爷貌似有心事。
+[Xiao Zishan][y001] called over the Gao family and Sun Chang and questioned them about whether anything special had happened these days, including at the Gao residence. After a long time of questioning, he only learned from Sun Chang that a "Little Eunuch Yang" from Beijing was coming to visit Master Gao recently, and Master Gao seemed to have something on his mind.
 
-　　高青知道了这事，愈加愁眉苦脸，一个人躲到前院里去扫地了。倒还是孙常镇定许多，上来禀告道：“这事情一时半会也不用着急，贼人即绑了[文老爷][y002]去，自然会派人送来书信。到时候或报官或赎人，老爷们可再做计较。”
+When Gao Qing learned of this, he became even more gloomy and went to the front yard to sweep the floor by himself. It was Sun Chang who was much calmer. He came up and reported, "There is no need to be anxious about this matter for the time being. Since the thieves have kidnapped [Master Wen][y002], they will naturally send someone to deliver a letter. At that time, whether to report to the officials or to ransom him, the masters can decide then."
 
-　　“报官？”[萧子山][y001]苦笑了一下，他们都是“非法入境分子”，怎么能去招惹大明的官府，更不用说他深知古代的治安管理思维，不是明火执仗杀人抢劫的大案子，官府才懒得计较。除非大把的用钱——那还不如赎人了。
+"Report to the officials?" [Xiao Zishan][y001] smiled bitterly. They were all "illegal immigrants." How could they provoke the officials of the Great Ming? Not to mention that he was well aware of the ancient mindset of public security. For cases that were not major crimes of robbery and murder in broad daylight, the officials couldn't be bothered. Unless a lot of money was used—in which case it would be better to just pay the ransom.
 
-　　“是，”孙常低声道，“老爷们不是大明人士不便出头，可请高老爷出面，由官府派人私下处置即可。”他看了一眼[萧子山][y001]，“高老爷在一府二县说话都兜得转。”
+"Yes," Sun Chang said in a low voice. "It is not convenient for the masters to come forward as you are not people of the Great Ming. You can ask Master Gao to come forward, and have the officials handle it privately." He glanced at [Xiao Zishan][y001]. "Master Gao has influence in one prefecture and two counties."
 
-　　“嗯。”[萧子山][y001]不置可否，心里却起了疑窦，这孙常没来的时候一切正常，来了几天[文总][y002]就不见了……
+"Hmm." [Xiao Zishan][y001] was noncommittal, but a doubt arose in his heart. Everything was normal before Sun Chang came. A few days after he came, [Chief Wen][y002] disappeared...
 
-　　正沉吟着，北炜走了进来。孙常赶紧退了出去。
+As he was pondering, Bei Wei walked in. Sun Chang quickly withdrew.
 
-　　“发现痕迹了！”
+"I've found traces!"
 
-　　“哦？哪里。”[萧子山][y001]精神一振。
+"Oh? Where?" [Xiao Zishan][y001]'s spirits lifted.
 
-　　“这伙人是从第三进院子后面的小路上翻墙进来的。墙檐上被拉掉了好些瓦片，都掉了一地。墙上还有磨擦的痕迹。”
+"This group of people came over the wall from the small path behind the third courtyard. Many tiles were pulled off the eaves of the wall and fell all over the ground. There are also friction marks on the wall."
 
-　　“出去也是？”
+"Did they leave the same way?"
 
-　　“是的，是原路返回的。我看了其他地方，没有翻墙的痕迹。”
+"Yes, they returned the same way. I checked other places, and there are no signs of climbing the wall."
 
-　　“我记得高老爷说过，这后面的小路，各个路口都有木栅门锁闭得，一般人进不了。”
+"I remember Master Gao said that the small path behind here has wooden gates at every intersection that are locked. Ordinary people can't get in."
 
-　　“我想他们不是从那里进来的，”北炜说，“前面进出都是大路，太显眼了。要是我就从城墙上过来。”
+"I don't think they came in from there," Bei Wei said. "The front entrance is a main road, too conspicuous. If it were me, I would come over from the city wall."
 
-　　“城墙？”
+"The city wall?"
 
-　　“是的。这里的宅子后院都挨着城墙。”北炜点点头，“虽然没有上下的坡道，但是城墙上平时几乎无人走动，只要能上去，简直就是环绕全城的高速公路了。”
+"Yes. The backyards of the residences here are all against the city wall." Bei Wei nodded. "Although there are no ramps up or down, there are almost no people walking on the city wall at ordinary times. As long as you can get up, it's practically a highway surrounding the whole city."
 
-　　“对对，这很有可能！”
+"Right, right, that's very possible!"
 
-　　“前天有人想潜进来偷听，我打过一个石子出去，那人也是往城墙方向逃过去的。我想很可能是同一伙人。”
+"The day before yesterday, someone tried to sneak in to eavesdrop. I threw a stone out, and that person also fled towards the city wall. I think it's very likely the same group of people."
 
-　　“看来是蓄谋的，不过谁会这么做呢？”
+"It seems it was premeditated. But who would do such a thing?"
 
-　　“这就不知道了。总而言之，我们得先把[文总][y002]找回来。等专业的来看了再做决定。”
+"That I don't know. In any case, we have to find [Chief Wen][y002] first. Let's wait for the professionals to take a look before we make a decision."
 
-　　“好，我们也得通知下高举，让他帮忙找人，他好歹是地头蛇，人头熟。”
+"Alright, we also have to notify Gao Ju and ask him to help find him. He is a local snake, after all, and knows a lot of people."
 
-　　“会和高举有关吗？”
+"Could it be related to Gao Ju?"
 
-　　“可能性不大吧，绑架了[文总][y002]对他有什么好处？”
+"The possibility is not high. What benefit would it be to him to kidnap [Chief Wen][y002]?"
 
-　　“不可不防。我再到四面看看，可惜了我的匕首了！”北纬忿忿然，这柄匕首可是从刀剑网上高价买来的——现在也和他的3515出的02作战靴一起不翼而飞了。
+"We can't be too careful. I'll go and look around again. What a pity about my dagger!" Bei Wei said resentfully. This dagger was bought at a high price from a knife and sword website—and now it had disappeared along with his Type 02 combat boots from 3515.
 
-　　[萧子山][y001]在书房里反复推想着里面的前因后果。无论怎么想，高老爷的嫌疑都是最大的，毕竟只有高老爷知道他们住在这里。但是动机何在？[萧子山][y001]深信这世界上的事情都是有动机的。高举这么做，他想得到什么？勒索钱财的话，现在的贸易活动里他已经赚了大钱。显然说不通，或者他想以[文总][y002]为人质，保证以后所有澳洲货物的独家垄断权，这倒是有可能。但不需要如此大费周章，又是跳墙、又是用迷香的。
+[Xiao Zishan][y001] repeatedly thought over the cause and effect of the matter in the study. No matter how he thought about it, Master Gao was the most suspicious. After all, only Master Gao knew they lived here. But what was the motive? [Xiao Zishan][y001] firmly believed that everything in this world had a motive. If Gao Ju did this, what did he want to get? If it was for money, he was already making a lot of money from the current trade. It obviously didn't make sense. Or perhaps he wanted to use [Chief Wen][y002] as a hostage to ensure the exclusive monopoly of all Australian goods in the future. That was possible. But there was no need to go to such great trouble, climbing walls and using knockout incense.
 
-　　跳墙、迷香……
+Climbing walls, knockout incense...
 
-　　说来说去，这还是江湖人物的所为么！
+In the end, this was still the work of people from the jianghu!
 
-　　[萧子山][y001]似乎有点明白过来了。他把孙常叫了进来。
+[Xiao Zishan][y001] seemed to understand something. He called Sun Chang in.
 
-　　“广州城里的城狐社鼠，你可熟悉？”
+"Are you familiar with the city foxes and den rats in Guangzhou?"
 
-　　“不熟，”孙常禀道，“小的不是本地人，且不是粤人，再者小的一直在高宅做工，高家对府中家人奴仆的身世背景逻查极严，与三教九流有涉者一律不收。”
+"Not familiar," Sun Chang reported. "I am not a local, nor am I from Guangdong. Furthermore, I have always worked in the Gao residence. The Gao family is extremely strict in investigating the background of their servants, and those involved with the three religions and nine schools of thought are not accepted."
 
-　　[萧子山][y001]点点头，这番自我表白也大体打消了他的嫌疑。孙常迟疑了一会，似乎又有话说。[萧子山][y001]道：“有什么话想说就说，我这里疑人不用，用人不疑。”
+[Xiao Zishan][y001] nodded. This self-declaration also largely dispelled his suspicion. Sun Chang hesitated for a moment, as if he had something more to say. [Xiao Zishan][y001] said, "If you have something to say, just say it. Here, I don't use people I suspect, and I don't suspect people I use."
 
-　　“是！”孙常受了鼓励，开口道，“小的有一主意。”
+"Yes!" Encouraged, Sun Chang opened his mouth, "I have an idea."
 
-　　“说吧。”
+"Go on."
 
-　　“这南海县里，有家起威镖局。”孙常说，“是家小镖局，镖路不厂，不过他们有一专业，就是坐店。”
+"In this Nanhai County, there is a Qiwei Escort Agency," Sun Chang said. "It's a small escort agency, and its escort routes are not long, but they have a specialty, which is 'sitting the shop.'"
 
-　　“坐店？”
+"Sitting the shop?"
 
-　　“是，老爷大约有所不知，开店的商家每每为街面游手混混骚扰勒索，就请镖师坐店弹压。”
+"Yes, master probably doesn't know. Shopkeepers are often harassed and extorted by street hooligans, so they hire escorts to sit in the shop to suppress them."
 
-　　“就是保安么。”[萧子山][y001]明白了。
+"So it's security," [Xiao Zishan][y001] understood.
 
-　　孙常不知道什么是保安，便说了个“是”，又接了下去：
+Sun Chang didn't know what security was, so he just said "yes" and continued:
 
-　　“坐店的镖师，对城市游手混混的情况极熟，若请他们帮忙，定可打探到消息。如只是一般的城狐社鼠所为，请他们救人也可。”
+"The escorts who sit the shop are extremely familiar with the situation of the city's hooligans. If we ask them for help, we can definitely find out some news. If it's just the work of ordinary city foxes and den rats, we can also ask them to rescue the person."
 
-　　注释：坐店这项镖局业务，只有在清代的北京城才有。其他地方尚未听说过。而且镖局这个行业，一般考据要在清代康熙年间才出现。我以为以宋、元、明三朝的商品经济情况，没有类似的行业或者组织是不可能的，但是一时间也找不到资料，就用了清代的资料了。
+Note: The business of "sitting the shop" for an escort agency only existed in Beijing during the Qing Dynasty. It has not been heard of in other places. Moreover, the escort agency industry is generally considered to have appeared during the Kangxi reign of the Qing Dynasty. I believe that given the commodity economy of the Song, Yuan, and Ming dynasties, it is impossible that there was no similar industry or organization, but I could not find any information for a while, so I used the information from the Qing Dynasty.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
