--- a/_posts/2009-9-30-1-03000.md
+++ b/_posts/2009-9-30-1-03000.md
@@ -1,100 +1,101 @@
 ---
 layout: post
-title: 第三十节 17世纪的推理
+title: "Section 30: 17th-Century Deduction"
 category: 1
 path: 2009-9-30-1-03000.md
 tag: [normal]
 ---
 
-　　“你有熟人在起威镖局？”[萧子山][y001]紧跟着问了一句。
+"Do you have an acquaintance at the Qiwei Escort Agency?" [Xiao Zishan][y001] immediately followed up with a question.
 
-　　“正是。”孙常坦然道，“他家的掌柜、镖师，都是小的的同乡。”原来这家起威镖局自上而下都是江西籍，走的镖路也只限于广州到江西南昌。镖局里的不少镖师还是孙常过去练武的同门师兄弟。
+"Indeed." Sun Chang said frankly, "The manager and escorts there are all from my hometown." It turned out that this Qiwei Escort Agency, from top to bottom, was staffed by people from Jiangxi, and their escort routes were limited to Guangzhou to Nanchang, Jiangxi. Many of the escorts in the agency were even Sun Chang's former martial arts brothers.
 
-　　是否请镖局介入，[萧子山][y001]不敢自作主张，毕竟涉及到的事体重大，迟疑片刻后，只说再议，吩咐他先把前后门户关闭谨守。
+Whether to involve the escort agency, [Xiao Zishan][y001] did not dare to make the decision himself. After all, the matter was of great importance. After hesitating for a moment, he only said that they would discuss it again and instructed him to first close and guard the front and back doors.
 
-　　这边执委会得了消息忙召开了紧急会议——居然有人敢绑架穿越众！是可忍熟不可忍。都想着要好好的给他们一点颜色看看——除了把冉耀这个前警察叔叔找了过来，还调集了几个满腹柯南道尔、满嘴克里斯蒂的推理爱好者，席亚洲干脆把藏起来的几支五连发猎枪起了出来，有人提议要不要做几个手榴弹给“给土人尝尝”，还有人准备做硫酸弹的。正群情汹汹间，[马千瞩][y005]站了出来，说：
+On this side, the Executive Committee, having received the news, hurriedly convened an emergency meeting—someone had dared to kidnap a transmigrator! This was intolerable. They all wanted to teach them a lesson—besides finding Ran Yao, the former police officer, they also mobilized several mystery enthusiasts full of Conan Doyle and Christie. Xi Yazhou simply took out the few five-shot shotguns that had been hidden away. Someone suggested making a few hand grenades to "give the natives a taste," and someone else was preparing to make sulfuric acid bombs. Just as the crowd was in an uproar, [Ma Qianzhu][y005] stood up and said:
 
-　　“不能去这么多人。”
+"We can't send so many people."
 
-　　“为什么？！”[王工][y003]正气急败坏，看到有人反对马上质问起来。
+"Why?!" [Engineer Wang][y003] was furious and immediately questioned the person who objected.
 
-　　“这么过去是添乱，不是帮忙。”[马千瞩][y005]说，“那边是明朝的广州，我们根本不熟悉，去那么多人有什么用？连个地图都没有，就告诉你们[文总][y002]关在哪里，你们找得到吗？”
+"Sending so many people over would be adding to the chaos, not helping," [Ma Qianzhu][y005] said. "That is Guangzhou of the Ming Dynasty. We are not familiar with it at all. What's the use of sending so many people? We don't even have a map. Even if we told you where [Chief Wen][y002] is being held, could you find him?"
 
-　　众人面面相觑，这个问题好像大家都没想到。
+The crowd looked at each other. It seemed that no one had thought of this problem.
 
-　　“明朝的事情，还是得明朝人来解决。这事情说白了就是需要情报，只要知道了[文总][y002]的下落，怎么处理都行，武力营救也好，拿钱赎人也好，都不成问题。这么多人乱哄哄的过去，[子山][y001]和[王工][y003]也不容易向那边的合作者解释吧。”
+"The problems of the Ming Dynasty should be solved by the people of the Ming Dynasty. To put it bluntly, this matter requires intelligence. As long as we know the whereabouts of [Chief Wen][y002], we can handle it in any way. A military rescue or a ransom, neither is a problem. With so many people going over in a chaotic mess, it wouldn't be easy for [Zishan][y001] and [Engineer Wang][y003] to explain to their collaborators over there either."
 
-　　“赎人？亏你想得出。”这边已经有人愤愤不平了，“下软蛋的事，不干！”这话引起了一阵嗡嗡的附和声。穿越众虽然满嘴都是：“不要低估了古人的智慧、”“古人也是很厉害的”云云，其实心里是充满了现代人的优越感——“文明发达的现代人”向“愚昧落后的古人”妥协，光想一想就会严重伤害了他们的心灵。
+"Ransom? I can't believe you thought of that." Someone was already indignant. "We don't do soft-egg things!" This remark caused a buzz of agreement. Although the transmigrators were full of talk like: "Don't underestimate the wisdom of the ancients," and "The ancients were also very capable," in their hearts they were filled with the superiority complex of modern people—for "civilized and advanced modern people" to compromise with the "ignorant and backward ancients," just thinking about it would seriously hurt their feelings.
 
-　　“如果能快速安全的解决，妥协未尝不是一个好办法。”[马千瞩][y005]坚持自己的看法，“武力营救，一则没有情报，二则恐怕会对[文总][y002]的人身安全带来威胁。最后，”他提醒大家，“我们的目标不是去和明朝黑社会斗狠。”
+"If it can be resolved quickly and safely, compromise is not necessarily a bad method," [Ma Qianzhu][y005] insisted on his own view. "A military rescue, for one, we have no intelligence, and for another, it might pose a threat to [Chief Wen][y002]'s personal safety. Finally," he reminded everyone, "our goal is not to fight tough with the Ming Dynasty's underworld."
 
-　　[马千瞩][y005]看大家的情绪稍微稳定了一点，接下去说：“我们两手准备。冉耀还是要去，查一下现场的情况，我相信他的刑事侦察知识足够用了。这也不是什么密室谋杀案，搞推理的就不必去了。”
+Seeing that everyone's emotions had stabilized a little, [Ma Qianzhu][y005] continued: "We will prepare with both hands. Ran Yao still has to go and check the situation at the scene. I believe his criminal investigation knowledge is sufficient. This is not some locked-room murder case, so the mystery buffs don't need to go."
 
-　　几个推理爱好者发出微弱的抗议声。
+A few mystery enthusiasts let out a weak protest.
 
-　　“万一要武力解决，那边已经有了北炜，我提议体育组再派二个人协助他就可以，人多了反而不好施展。”
+"In case a military solution is needed, Bei Wei is already there. I propose that the Sports Group send two more people to assist him. Too many people would be a hindrance."
 
-　　林深河挤了过来，说：“我也去吧。那支峨眉的小口径步枪给我带去。我在美国玩过狙击步枪，500米内基本弹无虚发。”
+Lin Shenhe squeezed over and said, "I'll go too. Let me take that Emei small-caliber rifle. I've played with sniper rifles in the US, and I can hit a target within 500 meters without missing a shot."
 
-　　“行，你也去。”
+"Alright, you go too."
 
-　　“就这些人吧。”看到还有人跃跃欲试，[马千瞩][y005]一挥手阻断了，对[王工][y003]说：“你和[子山][y001]说，还是要尽量利用明人的力量，不要太迷信武力了。”
+"That's all the people." Seeing that there were still people eager to try, [Ma Qianzhu][y005] waved his hand to stop them and said to [Engineer Wang][y003], "You tell [Zishan][y001] that we should still try to use the strength of the Ming people as much as possible and not be too superstitious about military force."
 
-　　“好。”
+"Alright."
 
-　　这边议论停当，大家忙着收拾装备。冉耀把他的照相机和刑事侦察记录本带上，本来他还有指纹收集工具，但是没用——大明没指纹档案可查。体育组带去了三支五连发猎枪，子弹不够，一时间也来不及装填新的弹药。每支只配了十发子弹。另外还带了一些侦察设备：夜视镜、无线信标，窃听器一时半会买不到，不过录音笔、麦克风和摄像头还是能搞来的。至于对讲机、烟幕筒、催泪弹、防毒面具杂七杂八的东西有用没用的都装了两个大背包。
+With the discussion settled here, everyone was busy packing their equipment. Ran Yao brought his camera and criminal investigation notebook. He originally had a fingerprint collection tool, but it was useless—the Great Ming had no fingerprint files to check. The Sports Group brought three five-shot shotguns. There wasn't enough ammunition, and there was no time to load new cartridges. Each gun was only equipped with ten rounds. They also brought some reconnaissance equipment: night vision goggles, wireless beacons. They couldn't buy eavesdropping devices in a short time, but they could still get recording pens, microphones, and cameras. As for walkie-talkies, smoke canisters, tear gas grenades, gas masks, and other miscellaneous things, they packed two large backpacks full of them, useful or not.
 
-　　冉耀随着[萧子山][y001]和孙常，把[文总][y002]的房间和整个院落都察看了一遍，又画了几张图。孙常见不到几个时辰，院子里又多出好几个澳洲人，比知道[文老爷][y002]被绑票都吃惊。眼见这个新来的澳洲人不说什么话，只闷头在屋子、院子里四处踅摸，一会爬梯子，一会又趴在地上拿个小玻璃镜子看，还不时拿个笔一样的东西在本子上涂抹，心想这大约就是澳洲的捕快了——只是纳闷这澳洲捕快怎么来得这么快。
+Ran Yao, along with [Xiao Zishan][y001] and Sun Chang, inspected [Chief Wen][y002]'s room and the entire courtyard, and also drew a few diagrams. Sun Chang was more surprised to see several more Australians appear in the courtyard in just a few hours than he was to learn that [Master Wen][y002] had been kidnapped. Seeing this new Australian not saying much, but just silently searching around the house and courtyard, one moment climbing a ladder, the next lying on the ground looking with a small glass mirror, and from time to time scribbling on a notebook with a pen-like thing, he thought to himself that this must be an Australian constable—only wondering how this Australian constable had arrived so quickly.
 
-　　花了一个多小时的勘察，冉耀已经大体明白了整个作案经过。
+After more than an hour of investigation, Ran Yao had generally understood the entire process of the crime.
 
-　　“这是一起多人合伙作案。”他在屋子里向杀气腾腾的营救小组介绍着情况，屋子里的大方桌竖起来临时充当黑板，黑漆的紫檀桌面被石灰饼子荼毒着。
+"This is a case of multiple people working together." He introduced the situation to the murderous-looking rescue team in the room. The large square table in the room was stood up to temporarily serve as a blackboard, and the black-lacquered rosewood tabletop was being ravaged by chalk.
 
-　　“这是犯罪分子进来的路线。”他在桌子上画着院子的平面图，“这里的院墙很高，差不多有7－8米，用人梯是进不来的，应该是用的一种飞爪，墙头上有明显的搭扣的抓痕，瓦片也有大量的掉落。”
+"This is the route the criminals took to get in." He drew a floor plan of the courtyard on the table. "The courtyard wall here is very high, almost 7-8 meters. It's impossible to get in with a human ladder. They should have used a kind of grappling hook. There are obvious scratch marks from the hooks on the top of the wall, and a large number of tiles have also fallen off."
 
-　　“真有飞爪这东西？”
+"Is there really such a thing as a grappling hook?"
 
-　　“有，我看过一些资料，迟到四五十年代还有使用这样工具的盗窃案件发生。”
+"Yes, I've seen some materials. Theft cases using such tools still occurred as late as the 40s and 50s."
 
-　　“罪犯进来以后，首先在外院用迷香熏倒了仆人，又进来逐一熏倒我们的四位同志，方向是由东往西进行的，在外面等候若干时间之后，才从容的搜查了各个房间。
+"After the criminals got in, they first used knockout incense in the outer courtyard to knock out the servants, then came in and knocked out our four comrades one by one. The direction was from east to west. After waiting outside for some time, they then leisurely searched the various rooms.
 
-　　“然后他们又扭断了穿越点的房间挂锁，企图撬开栅栏，栅栏上至少有三到四处用铁器撬动的痕迹。看磨损的痕迹很可能是粗制的刀或者其他类似的长条型铁制品。
+"Then they twisted off the padlock of the room at the crossing point and tried to pry open the grate. There are at least three or four places on the grate with marks of being pried with an iron tool. Looking at the wear marks, it is very likely a crude knife or other similar long iron product.
 
-　　“最后他们带走了昏迷中的[文总][y002]，路线是直接打开后院的门出去的。
+"Finally, they took away the unconscious [Chief Wen][y002]. The route was to directly open the back gate of the courtyard and go out.
 
-　　“虽然痕迹不够明显，但是从院子的泥地、墙面上的擦痕提取的脚印来看，至少有三组不同大小的脚印，院墙外另外有一组脚印，因此推断至少为四人。犯罪分子的身高从1.55米到1.60米之间。他们携有专门的爬墙工具、武器和昏迷性药品，应该是职业犯罪分子。
+"Although the traces are not obvious, from the footprints extracted from the mud in the courtyard and the scuff marks on the wall, there are at least three sets of footprints of different sizes. There is another set of footprints outside the courtyard wall, so it is inferred that there were at least four people. The height of the criminals is between 1.55 meters and 1.60 meters. They carried special wall-climbing tools, weapons, and anesthetic drugs. They should be professional criminals.
 
-　　“有一个比较奇特的现象，就是提取到的四组脚印里有一组是赤足。虽然古人赤脚走路是一种常见现象。但这里是广州城，不是什么荒僻小县，这一点可以作为侦察的突破口。”
+"There is a rather peculiar phenomenon, which is that one of the four sets of footprints extracted was barefoot. Although it is a common phenomenon for ancient people to walk barefoot, this is Guangzhou city, not some remote small county. This point can be used as a breakthrough for the investigation."
 
-　　“是指那些习惯赤足的社会人群吗？”
+"Do you mean those social groups that are accustomed to being barefoot?"
 
-　　“对，至少说明这伙犯罪分子里有习惯赤足的人，这不大可能是某个人特殊的嗜好，应该是某个社会群体共有的习惯。”
+"Yes, at least it shows that there are people in this group of criminals who are accustomed to being barefoot. This is unlikely to be a special hobby of a certain individual, but should be a common habit of a certain social group."
 
-　　“那会是什么人呢？”大家都犯疑了。
+"Then who could they be?" Everyone was puzzled.
 
-　　“我不是历史学家。”冉耀无可奈何的说。其实这案子要放在现代毫无难点，这伙人留下的痕迹在现代刑侦技术下简直和没穿裤子一样。可惜这是17世纪的大明，即没有指纹档案也没有犯罪记录案卷可以查，他对这个古代的城市社会状况更是一无所知。常用的办案手法一样也派不上用处。
+"I am not a historian," Ran Yao said helplessly. In fact, this case would have no difficulty in modern times. The traces left by this group of people would be like they were not wearing pants under modern criminal investigation technology. It was a pity that this was the Great Ming of the 17th century. There were neither fingerprint files nor criminal record files to check, and he knew nothing about the social situation of this ancient city. The usual methods of handling cases were all useless.
 
-　　大家来有些失望，原以为专业刑事侦察人员一出马，这类宵小无赖马上显出原型。看来根本不是这么回事。现代刑事侦察很大程度上依赖长期积累起来的情报资料和档案。
+Everyone was a little disappointed. They had originally thought that as soon as a professional criminal investigator was on the case, these petty scoundrels would immediately show their true colors. It seemed that it was not the case at all. Modern criminal investigation relies heavily on long-accumulated intelligence data and archives.
 
-　　“还能看出什么吗？比如动机什么的。”[萧子山][y001]继续追问，“是不是蓄谋，还是临时起意。”
+"Can you see anything else? For example, the motive or something." [Xiao Zishan][y001] continued to ask. "Was it premeditated, or was it a spur-of-the-moment thing?"
 
-　　“是蓄谋。从还原整个犯罪过程来看：犯罪分子对院落情况了解十分清楚。这里大大小小有二十多间房，只有住人的房屋内才施放了迷香，那些不住人的房间窗户上，我都没发现药孔。
+"It was premeditated. From reconstructing the entire crime process, the criminals had a very clear understanding of the courtyard situation. There are more than twenty rooms here, large and small, but knockout incense was only used in the inhabited rooms. I didn't find any drug holes on the windows of the uninhabited rooms.
 
-　　“之所以用迷香，显然是知道你们有很强的防卫能力。否则还真没这么容易得手——[文总][y002]可是个随时随地都带防狼喷剂的人。
+"The reason they used knockout incense was obviously because they knew you had strong defensive capabilities. Otherwise, it would not have been so easy to succeed—[Chief Wen][y002] is a person who carries pepper spray with him at all times.
 
-　　“而且北炜介绍情况的时候也说了，前几天你们遭遇过有人潜入的事情。这应该是犯罪分子的踩点行动。
+"And when Bei Wei introduced the situation, he also said that you had encountered someone sneaking in a few days ago. This should have been the criminals' reconnaissance operation.
 
-　　“至于说动机，比较费解。”冉耀摸了摸下巴，“从失窃物品清单来看显然是为了财物而来，但是单单把[文总][y002]绑走，似乎又是有目的的绑架。”
+"As for the motive, it is rather puzzling." Ran Yao rubbed his chin. "From the list of stolen items, it is clear that they came for property, but to kidnap only [Chief Wen][y002] seems to be a targeted kidnapping."
 
-　　“他们知道[文总][y002]的澳洲海商的身份么？”
+"Do they know [Chief Wen][y002]'s identity as an Australian sea merchant?"
 
-　　“我认为肯定知道。”冉耀指了指失窃清单，“这伙人感兴趣的不仅是银子，还有你们的所谓澳洲货——不少明代的细软他们反而没拿，倒把你们的鞋子、袜子、签字笔什么的现代小东西都偷走了。显然是有备而来的。”
+"I think they definitely know." Ran Yao pointed to the stolen goods list. "This group of people is not only interested in silver, but also in your so-called Australian goods—they didn't take many of the Ming Dynasty's fine soft goods, but instead stole your modern small things like shoes, socks, and pens. It is clear that they came prepared."
 
-　　“你的意思是？”
+"What do you mean?"
 
-　　“这事情不是盗窃、也不是绑票这么简单。”冉耀摇了摇头，“我觉得绑走[文总][y002]，未必是出于勒索的目的。”
+"This matter is not as simple as theft or kidnapping for ransom," Ran Yao shook his head. "I don't think kidnapping [Chief Wen][y002] was necessarily for the purpose of extortion."
 
-　　大家小声商量了一会，还是同意使用明朝人的力量去打探消息。[萧子山][y001]便叫孙常：把起威镖局的掌柜叫来。
+Everyone discussed in a low voice for a while, and still agreed to use the power of the Ming people to gather information. [Xiao Zishan][y001] then called Sun Chang: "Call the manager of the Qiwei Escort Agency here."
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
