--- a/_posts/2009-9-4-1-00400.md
+++ b/_posts/2009-9-4-1-00400.md
@@ -1,92 +1,93 @@
 ---
 layout: post
-title: 第四节 掘金——澳洲海商
+title: "Section 4: Digging for Gold - The Australian Sea Merchants"
 category: 1
 path: 2009-9-4-1-00400.md
 tag: [normal]
 ---
 
-　　“靠，真是像坐过山车啊。”[萧子山][y001]心有余悸，小声的说。
+"Damn, that was like a roller coaster ride," [Xiao Zishan][y001] said in a low voice, still shaken.
 
-　　“富贵险中求。”[王洛宾][y003]依然把手放在口袋里，[萧子山][y001]知道他从刚才到现在都握着那电击器。
+"Fortune is sought in danger," [Wang Luobin][y003] said, his hand still in his pocket. [Xiao Zishan][y001] knew he had been gripping the stun gun the whole time.
 
-　　“说什么呢，淡定，淡定。”[文总][y002]的鼻子上也出了不少汗。
+"What are you talking about? Calm down, calm down." [Chief Wen][y002] also had beads of sweat on his nose.
 
-　　本来还算过得去的穿越计划一开始就出了问题，[文德嗣][y002]刚把虫洞的出口收入包中，就听得狗的狂叫，吓得三个人腿肚子都软了，一阵抓狂。幸好[王洛宾][y003]一直把电击器拿在手里，闻听身后有风声，赶紧猛按按钮，反手一抄，瞎猫碰死耗子的把一只正欲扑上来撕咬的恶狗电的毛发直树，口吐白沫，四脚朝天，大约连带又麻到了后续的，群犬只是狂吠，不再上来。没等三人想下一步如何，院门一开，早涌进来七八个青衣家丁，手里刀枪棍棒齐全，还有个胳膊上缠着火绳的火铳手，黑洞洞的枪口直冲着这三个一脑袋发财梦的位面旅行者。
+The reasonably well-thought-out transmigration plan had gone wrong from the very beginning. Just as [Wen Desi][y002] had put the wormhole exit into his bag, they heard the frantic barking of dogs, which scared the three of them so much their legs went soft, and they panicked. Fortunately, [Wang Luobin][y003] had been holding the stun gun. Hearing the sound of wind behind him, he quickly pressed the button and swung his hand back, and like a blind cat catching a dead mouse, he electrocuted a vicious dog that was about to pounce and bite, making its hair stand on end. It foamed at the mouth and fell on its back with its four legs in the air. The shock probably also stunned the ones behind it, as the pack of dogs just barked wildly and didn't advance. Before the three could think of their next move, the courtyard gate opened, and seven or eight household servants in green clothes rushed in, fully armed with swords, spears, and clubs. There was even a musketeer with a lit matchcord wrapped around his arm, the dark muzzle of his gun aimed straight at these three interdimensional travelers who were dreaming of getting rich.
 
-　　时空之旅遇到的第一批异时空的人显然不甚友好，不仅不友好，连性命一时都危矣。黑洞洞的鸟铳对着自己，这样的体会对这几个宅男来说还是平生第一遭。
+The first group of people from another time they encountered on their journey through time and space were clearly not very friendly. Not only were they not friendly, but their lives were also in immediate danger. Having the dark muzzle of a musket pointed at them was a first-time experience for these nerds.
 
-　　他们平日里论及古代的火器的时候对明代的鸟铳很鄙夷，觉得其粗制滥造，射程威力都不足道。然而此时双方不过二十多步的距离，黑洞洞的枪口对着自己，想必再烂的鸟铳都能打个满脸开花。慌的都不知道干啥好了，[文德嗣][y002]想好的一篇开场白也给吓得生生吞了下去。
+In their usual discussions of ancient firearms, they were very contemptuous of the Ming Dynasty's muskets, considering them to be crudely made and lacking in range and power. However, at this moment, with only a distance of twenty-odd paces between them, and the dark muzzle pointed at them, they figured that even the worst musket could blow their faces to smithereens. They were so panicked they didn't know what to do. The opening speech that [Wen Desi][y002] had prepared was swallowed back down in fear.
 
-　　幸好家丁们看到几条狗的下场，畏缩了一下，双方对峙片刻，[文德嗣][y002]想此时要丢出烟幕弹虽然脱身不难，但时空倒爷的生涯不就就此完结，何谈以后的统一世界再造中华的大业！想到这里，豪气自胆边生，高举双手，用广东话连说带比，又丢过去一个连镜粉盒，以示自己并无恶意。
+Fortunately, the servants hesitated after seeing the fate of the dogs. The two sides faced off for a moment. [Wen Desi][y002] thought that although it would not be difficult to escape by throwing a smoke bomb at this time, wouldn't his career as an interdimensional trader be over? How could he then talk about the great cause of unifying the world and rebuilding China in the future! At this thought, a heroic spirit rose from his gall bladder. He raised his hands high, speaking and gesturing in Cantonese, and threw over another powder box with a mirror to show that he had no ill intentions.
 
-　　没想到粉盒的作用如此之大，没多久，三人便由被刀枪相向，变成了座上宾。
+Unexpectedly, the powder box had such a great effect. Before long, the three of them went from being held at sword and gunpoint to being honored guests.
 
-　　“老王，你说他们会不会是圈套？把我们骗到这里来捉拿？”[萧子山][y001]偷偷张望了下四周。这可是真正的明代建筑，他们屁股下面坐的，也是真正的明代家具，随便哪一件拿到本时空都能卖个好价钱，可是此刻谁也没心思欣赏。
+"Old Wang, do you think this is a trap? Did they lure us here to capture us?" [Xiao Zishan][y001] secretly glanced around. This was a real Ming Dynasty building, and what they were sitting on was real Ming Dynasty furniture. Any piece of it could be sold for a good price in their own time, but at this moment, no one was in the mood to appreciate it.
 
-　　“要动手后院他们也能动手……”
+"If they wanted to make a move, they could have done it in the backyard..."
 
-　　“大家小心就是，对了，不要喝茶。”[文德嗣][y002]小声说，“看这家的家丁，估计主人也是搞走私的，这种人多半心黑手狠，当心对方起了歹念。”
+"Let's just be careful. By the way, don't drink the tea," [Wen Desi][y002] said in a low voice. "Looking at the servants of this family, the master is probably also a smuggler. This kind of person is mostly black-hearted and ruthless. Be careful he doesn't get any evil ideas."
 
-　　“嗯，明白。”
+"Yes, understood."
 
-　　“[子山][y001]，一会我要一丢烟幕弹，你就赶快帮我把虫洞拿出来。咱们立马扯乎。”
+"[Zishan][y001], in a moment, if I throw a smoke bomb, you quickly help me get the wormhole out. We'll get out of here immediately."
 
-　　“明白。”
+"Understood."
 
-　　正小声商量着，见外面七八个家丁拥着一位中年华服男人进来。[萧子山][y001]他们刚才忙乱了一阵，刚刚心平了些，此刻好奇心大涨——这可是真真正正的大明之人那！直勾勾的三双眼睛，望着这位保养的白白净净的中年男人。
+As they were whispering, they saw a middle-aged man in fine clothes enter, surrounded by seven or eight servants. [Xiao Zishan][y001] and the others had just been in a flurry of activity and had just calmed down a bit. Now, their curiosity was greatly piqued—this was a real, genuine person from the Great Ming! Three pairs of eyes stared intently at this well-maintained, fair-skinned middle-aged man.
 
-　　高老爷适才打开盒子，便大吃了一惊。他贩卖洋货二十多年，见多识广，且不说这粉盒非瓷非玉的甚为难得，里面嵌镶的，便是一面价值连城的水晶镜子。这些年来他也只见过几次而已，虽然尺寸都比这个大不少，但论及晶荧光亮又不及它。他听得佛郎机海商说过，这水晶镜子泰西只出在一城，作坊建在岛上，四周守卫森严，一向属于秘制，便是佛郎机国内也难得一见，更不用说在这广州城了。
+Master Gao had just opened the box and was greatly surprised. He had been dealing in foreign goods for more than twenty years and was very knowledgeable. Not to mention that the powder box, being neither porcelain nor jade, was very rare, the mirror embedded inside was a priceless crystal mirror. He had only seen a few in all these years, and although they were much larger than this one, they were not as bright and clear. He had heard from the Frankish sea merchants that these crystal mirrors were only produced in one city in the West. The workshops were built on an island, heavily guarded, and the craft was always a secret. They were rare even in the Frankish country, let alone in this city of Guangzhou.
 
-　　这三名倭人，好大的手面！高老爷心中揣度，莫非是日本国内哪位名主的使者？转念一想，倭人自己日用尚且不足，百货十之八九都要唐船贩运，怎会有如此的奇珍？
+These three Japanese, what a grand gesture! Master Gao pondered in his heart. Could they be envoys from some famous lord in Japan? On second thought, the Japanese themselves had barely enough for their daily use, and nine out of ten of their goods had to be transported by Tang ships. How could they have such a rare treasure?
 
-　　既然对方能不惜重金的以此示好，无论如何都得去见上一见。高老爷已经嗅到了银子的味道。慎重起见他还是带了自己手下身手最好的护卫家丁同去。
+Since the other party was willing to show such goodwill with such an expensive gift, he had to meet them no matter what. Master Gao could already smell the silver. To be cautious, he still brought his most skilled household guards with him.
 
-　　劈面一见，高老爷又怔住了，这伙人不是倭人！
+When they met face to face, Master Gao was stunned again. This group of people were not Japanese!
 
-　　广州是五方杂处之地，倭人他见得多了，这三人虽不蓄发，却不是倭人常见的髡发，内中一个头发剃极短，仿佛头陀一般，另二个稍长。衣服颇为古怪，对襟的衫褂，短不及膝……这身装扮，倭人没有，佛郎机也没有。
+Guangzhou was a place where people from all five directions gathered, and he had seen many Japanese. Although these three men had short hair, it was not the common shaved head of the Japanese. One of them had his hair cut very short, like a monk, while the other two had slightly longer hair. Their clothes were rather strange, a jacket that opened in the front, short and not reaching the knees... This attire was not worn by the Japanese, nor by the Franks.
 
-　　而且这三人的身材高大，根本不是倭人那样的矮小。个个都在五尺五寸以上，内中一个竟然有六尺之躯。
+Moreover, these three men were tall, not short like the Japanese. Each was over five feet five inches tall, and one of them was even six feet tall.
 
-　　看其样貌：皮肤白净，手脚也不粗大，显然平日里都是养尊处优之人。观其神情，虽有些惴惴，但绝无卑微低下之感，举手投足间别有一番自信。
+Looking at their appearance: their skin was fair, and their hands and feet were not rough. It was clear that they were people who lived in comfort. Looking at their expressions, although they were somewhat apprehensive, there was no sense of humility or lowliness. There was a certain confidence in their every move.
 
-　　高老爷在商界纵横多年，也算眼光老辣之人，看这三人，却瞧不出什么路数。
+Master Gao had been in the business world for many years and had a sharp eye, but looking at these three men, he couldn't figure them out.
 
-　　正疑惑着，见三人直勾勾地看着自己，眼神极度古怪，心里一阵发毛，不由倒退了一步，心想这几个莫非有龙阳之好，怎么看他这样一个男人也如此的糁人。
+As he was wondering, he saw the three men staring at him with extremely strange eyes. A chill ran down his spine, and he couldn't help but take a step back, thinking to himself, could these men have the passion of Longyang? Why would they look at a man like him with such a creepy gaze?
 
-　　这边[萧子山][y001]他们看那中年人面色变换不定，也有些疑虑。这人看起来有五十来岁，头戴四方平定巾，身穿绸圆领。相貌周正，蓄着淡淡一缕胡须，白净的面孔微微发胖。和身边那几个又黑又瘦小的家丁形成了鲜明的对比。
+On this side, [Xiao Zishan][y001] and the others saw the middle-aged man's expression change uncertainly, and they also had some doubts. This man looked to be in his fifties, wearing a square flat-topped scarf and a silk round-collared robe. His features were regular, and he had a light beard. His fair face was slightly plump. He was a stark contrast to the dark, thin servants around him.
 
-　　高老爷冲着[文德嗣][y002]拱了拱手，问道：“不知好汉怎么称呼？”
+Master Gao cupped his hands towards [Wen Desi][y002] and asked, "May I ask what to call you, brave sirs?"
 
-　　[文德嗣][y002]的冲锋衣因为下摆较长，质地看起来类似绸缎，与两个短衣帮的粗布衣差别明显，便被高老爷认作是为首的。
+[Wen Desi][y002]'s windbreaker, because its hem was longer and its texture looked like silk, was clearly different from the coarse cloth clothes of the other two short-jacketed men, so Master Gao took him to be the leader.
 
-　　这话一出，[文德嗣][y002]立刻听出来，这不是广州话，倒有些现代南京话的口音。于是操着普通话道：“我等自海外来，夜不辨路，偶入贵宅。请问此地是什么地方？”
+As soon as these words were spoken, [Wen Desi][y002] immediately recognized that this was not Cantonese, but had a bit of a modern Nanjing accent. So he spoke in Mandarin: "We have come from overseas, and lost our way at night, accidentally entering your esteemed residence. May I ask what place this is?"
 
-　　高老爷虽然听得不甚明白，不过凭直觉，这些人对自己没恶意，他毕竟走惯江湖的，慢慢问道：“几位好汉自哪里来？”
+Although Master Gao didn't understand very well, he had a gut feeling that these people meant him no harm. After all, he was experienced in the ways of the world. He slowly asked, "Where have you brave sirs come from?"
 
-　　既然言语上能够沟通，双方连说带写的互通了姓名，[文德嗣][y002]便将早已商量好的套路说了出来。
+Since they could communicate verbally, the two sides exchanged names through a combination of speaking and writing. [Wen Desi][y002] then recited the story they had already agreed upon.
 
-　　“我等先辈皆是中华人士，崖山之后，逃亡海外。曾在渤泥创下一番家业，奈何那国主见汉人势大，屡不容于我，只得再次出海向南，直到了万里海外的澳洲，如今也有二百余年了。”
+"Our ancestors were all people of China. After the Battle of Yamen, they fled overseas. They once established a family business in Borneo, but alas, the ruler of that country saw that the Han people were becoming powerful and repeatedly would not tolerate us. We had no choice but to go to sea again, heading south, until we reached Australia, tens of thousands of li overseas. It has been more than two hundred years now."
 
-　　高老爷沉吟片刻，道：“这么说你们并非倭人了？”
+Master Gao pondered for a moment and said, "So you are not Japanese?"
 
-　　“我等乃是华夏之民，怎会是倭人？！”[王洛宾][y003]不满意的插话道。
+"We are people of China, how could we be Japanese?!" [Wang Luobin][y003] interjected with dissatisfaction.
 
-　　高老爷抬了抬眼皮，这伙海外之人真是不懂规矩，一个下人也随便插话。
+Master Gao raised his eyelids slightly. This group of people from overseas really didn't know the rules. A mere subordinate was interrupting at will.
 
-　　“我等并非倭人。”[文德嗣][y002]道，他见这明朝员外老爷对这套说辞没什么异议，愈发大胆起来，便说那澳洲原是蛮荒之地，只有少量的土人，先辈在那里披荆斩棘，终成乐土，安居乐业。历代先人都心怀故土，所以派遣他们几个携带货物一路经商过来看看。
+"We are not Japanese," [Wen Desi][y002] said. Seeing that this Ming Dynasty country gentleman had no objection to this story, he became bolder and said that Australia was originally a barren land with only a few natives. Their ancestors had blazed a trail there and finally created a paradise where they lived and worked in peace. For generations, their ancestors had cherished the memory of their homeland, so they sent a few of them with goods to come and see.
 
-　　其实这话里的漏洞是很多的，他们怎么进的城，船又停泊在哪里，都没说明。不过正如[文德嗣][y002]所预计的那样：有时候你只要有一个说法并且坚持就可以。
+In fact, there were many loopholes in this story. How they entered the city, and where their ship was docked, were not explained. But just as [Wen Desi][y002] had predicted: sometimes you just need to have a story and stick to it.
 
-　　高老爷频频点头，渤泥这个地方他是知道的，每年都有好几艘洋船（明代说的洋船并不是外国船的意思，而是通洋之船，即明代商人贸易船只）去那里，从没听说过这个事情，不过他懒得较真，反正都是好几百年前的事情，谁能搞得明白！再说他对渤泥还是澳洲都没兴趣。
+Master Gao nodded frequently. He knew of the place Borneo. Every year, several foreign ships (in the Ming Dynasty, "foreign ships" did not mean foreign ships, but ships that sailed to foreign lands, i.e., Ming merchant trading ships) went there. He had never heard of this matter, but he was too lazy to be serious about it. Anyway, it was a matter of several hundred years ago, who could figure it out! Besides, he was not interested in Borneo or Australia.
 
-　　“……我等不明路途，误入贵宅，惊动宝方，恕罪恕罪。”[文德嗣][y002]说着，照猫画虎的行了个拱手之礼，“我们自海外来，请问这里是什么地方？”
+"...We did not know the way and accidentally entered your esteemed residence, disturbing your honorable place. Please forgive us, please forgive us." As [Wen Desi][y002] spoke, he clumsily performed a cupped-hand salute. "We have come from overseas. May I ask what place this is?"
 
-　　“好说好说，”高老爷道。这几个人身怀重宝，又能深夜入城，极不简单。这套说辞姑妄听之就是，“这里是大明广州府，南海县。”
+"It's nothing, it's nothing," Master Gao said. These people were carrying great treasures and could enter the city late at night; they were by no means simple. He would just take their story with a grain of salt. "This is Guangzhou Prefecture, Nanhai County, of the Great Ming."
 
-　　[文德嗣][y002]紧接着又追问一句：“不知今日是何年何月何日？”
+[Wen Desi][y002] immediately followed up with another question: "May I ask what year, what month, and what day it is today?"
 
-　　高老爷一怔，答道：“天启七年二月。”
+Master Gao was taken aback for a moment, then replied, "The second month of the seventh year of Tianqi."
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
