--- a/_posts/2009-9-5-1-00500.md
+++ b/_posts/2009-9-5-1-00500.md
@@ -1,85 +1,86 @@
 ---
 layout: post
-title: 第五节 神话的破灭
+title: "Section 5: The Myth is Shattered"
 category: 1
 path: 2009-9-5-1-00500.md
 tag: [normal]
 ---
 
-　　天启七年，公元1627年。
+The seventh year of Tianqi, 1627 AD.
 
-　　本月，后金攻朝鲜，迫使朝鲜降服，大明的海东藩属陷入女真之手。
+This month, the Later Jin attacked Korea, forcing it to submit. The Great Ming's vassal state to the east of the sea fell into the hands of the Jurchens.
 
-　　五月，皇太极攻宁远、锦州，被明军击退，时称宁锦大捷。皇太极由此改变战略，决意绕开宁锦－山海关防线，直接入关侵掠。随后的崇祯十七年间，五度入关，中原大地生灵涂炭，早已经风雨飘摇的大明江山雪上加霜。
+In the fifth month, Huang Taiji attacked Ningyuan and Jinzhou but was repelled by the Ming army, a victory known at the time as the Great Victory of Ning-Jin. This led Huang Taiji to change his strategy, deciding to bypass the Ning-Jin-Shanhai Pass defense line and directly invade and plunder within the pass. In the subsequent seventeen years of the Chongzhen reign, he would invade through the pass five times, bringing devastation to the Central Plains and adding frost to the snow for the already precarious Ming Dynasty.
 
-　　七月，天启帝重病，权倾一时的九千岁的踏上了末路。这年的十一月，魏忠贤籍没自杀。阉党的覆灭，给晚明的政治天空带来了一瞬的希望，又流星一般的消失。割掉一个烂疮，并不能让早已浑身溃烂的病人起死回生。大明——这个汉人最后的中原王朝再也无力回天，踏上了覆灭的道路。
+In the seventh month, the Tianqi Emperor fell gravely ill, and the once all-powerful Nine-Thousand-Year-Old began his final journey. In the eleventh month of that year, Wei Zhongxian's property was confiscated, and he committed suicide. The fall of the eunuch faction brought a fleeting moment of hope to the political sky of the late Ming, only to disappear like a shooting star. Cutting out a rotten sore could not bring a patient already riddled with decay back to life. The Great Ming—this last Han Chinese dynasty of the Central Plains—was powerless to turn the tide and embarked on the road to destruction.
 
-　　穿越来的三人，一时无语，气氛有些凝重。
+The three transmigrators were speechless for a moment, the atmosphere somewhat heavy.
 
-　　高老爷轻咳一声，捻着胡子，慢慢问道：“贵客即是海商，可有货物要出售？”
+Master Gao coughed lightly, stroked his beard, and slowly asked, "Since you esteemed guests are sea merchants, do you have any goods to sell?"
 
-　　[文德嗣][y002]和[萧子山][y001]对视一眼——说到正题上了。这个眼神，被高老爷敏锐的捕捉到了。
+[Wen Desi][y002] and [Xiao Zishan][y001] exchanged a glance—they were getting to the point. This glance was keenly caught by Master Gao.
 
-　　“我等确是有一些货物想来贩售，只是初来乍到，不明途径……”[文德嗣][y002]故作为难状。
+"We do indeed have some goods we would like to sell, but we are new here and do not know the channels..." [Wen Desi][y002] feigned difficulty.
 
-　　“哈哈，这个好说，”高老爷笑道，“在下在这广州城里，也经营了多年的番货买卖了，尊驾若是信得过，此事倒可效劳。”
+"Haha, that's easy to say," Master Gao laughed. "I have been in the business of foreign goods in this city of Guangzhou for many years. If you, sir, can trust me, I can be of service in this matter."
 
-　　“那就有劳高老爷了。”[文德嗣][y002]大喜。
+"Then I shall trouble you, Master Gao," [Wen Desi][y002] said with great joy.
 
-　　“这是我们的货样。”[萧子山][y001]轻声说着，从背包里一一取出物件来。
+"These are our samples," [Xiao Zishan][y001] said softly, taking out the items from his backpack one by one.
 
-　　见识过那粉盒之后，高老爷对这些人的货物怀着极大的兴趣。首先是那种他见过的粉盒，只不过这个是一种发腻的浅绿色，然后是完全透明的玻璃杯，上面还有些好看的图案，这个杯子虽然透明度远高于任何高老爷见过的杯子，但并未超出他的认知范围，所以他有点失望。接着是几个各式瓷器，模样和釉色都不出众，拿起一掂觉得很轻，手感也不是瓷器的冰凉便知道和瓷器不是一回事，正想着此物不甚值钱的时候，[萧子山][y001]似乎知道他的想法，将几个碗盏都推落到地上。高老爷吃了一惊，却看到这些东西在他的方砖铺地上没有摔得四分五裂，只是转了几个圈子，毫发无损。
+Having seen the powder box, Master Gao was extremely interested in these people's goods. First was the kind of powder box he had seen before, only this one was a sickly pale green. Then there were completely transparent glass cups with some nice patterns on them. Although the transparency of these cups was far superior to any cup Master Gao had ever seen, it did not exceed his scope of cognition, so he was a little disappointed. Next were a few miscellaneous porcelain items. The appearance and glaze were not outstanding. Picking one up, he felt it was very light, and the feel was not the coldness of porcelain, so he knew it was not the same thing. Just as he was thinking that this item was not very valuable, [Xiao Zishan][y001] seemed to know his thoughts and pushed the several bowls and dishes to the ground. Master Gao was startled, but he saw that these things did not shatter into pieces on his tiled floor, but just rolled around a few times, completely unscathed.
 
-　　一旁的家丁赶紧把东西捡起来，高老爷劈手夺过，仔仔细细的拿着看了半天，没有半点裂纹缺口，心道这些人的东西果然古怪。
+A nearby servant quickly picked up the items. Master Gao snatched them over and examined them carefully for a long time. There was not a single crack or chip. He thought to himself that these people's things were truly strange.
 
-　　接着是一些透明的盒子，有方有圆，都配着可以盖紧的盖子，虽然很象高老爷从佛郎机人手里买来的玻璃器，却轻得多，也不怕摔。
+Next were some transparent boxes, both square and round, all with tight-fitting lids. Although they were very similar to the glassware Master Gao had bought from the Franks, they were much lighter and not afraid of being dropped.
 
-　　还有一些闪闪发亮的小刀，有点象玻璃却又和油布般不会透水的料子做得连帽斗篷……都是一些稀奇古怪的东西。高举看着这琳琅满目的一桌东西，心里又惊又喜，喜得是拿出来的货物都是珍稀奇物，一转手就能能卖个好价钱，怕得是这伙人行为鬼祟，底细不清。沉吟片刻，赚大钱的欲望压倒了顾虑，转眼一想，自己就是做这通洋贩私的买卖，佛郎机人还是澳洲人，又有什么关系。这几个人既然到得他府中，哪有把横财推出去的道理。
+There were also some shiny little knives, and a hooded cloak made of a material that looked a bit like glass but was waterproof like oilcloth... all sorts of strange things. Gao Ju looked at the dazzling array of things on the table, his heart filled with both surprise and joy. He was happy that the goods brought out were all rare and strange things that could be sold for a good price with a quick turnover. He was afraid that this group of people behaved furtively and their background was unclear. After a moment of hesitation, the desire to make a big profit overcame his misgivings. On second thought, he himself was in the business of smuggling foreign goods. Whether they were Franks or Australians, what difference did it make? Since these people had come to his mansion, there was no reason to push away a windfall.
 
-　　“不知这些奇货，欲售多少银钱？”定下心来，高老爷小心翼翼地问道。
+"I wonder how much silver you wish to sell these strange goods for?" Having made up his mind, Master Gao asked cautiously.
 
-　　[文德嗣][y002]指着穿越小说中惯用的奇货：玻璃杯，道：“这杯子，每个一千两。”
+[Wen Desi][y002] pointed to the commonly used wonder-product in transmigration novels: the glass cup, and said, "This cup, one thousand taels each."
 
-　　照这三人的想法，这个白白净净的明代老爷应该会毫不犹豫的买下这件稀世奇珍。没想到却见他满脸诧异，犹如见到几个疯子一般地看着他们。
+According to the three men's thinking, this fair-skinned Ming Dynasty master should have bought this rare treasure without hesitation. Unexpectedly, they saw his face full of astonishment, looking at them as if they were a few madmen.
 
-　　“这个，着实贵了。”高老爷连连摇头，“这等玻璃器具，濠镜澳的佛郎机人也有贩来，大件玻璃碗瓶，不过三两一个。小得也不过一两一个，这个杯子……”说着连连摇头，言下之意最多也就三两。
+"This is truly expensive," Master Gao shook his head repeatedly. "This kind of glassware, the Franks in Macau also sell. A large glass bowl or bottle is no more than three taels each. A small one is no more than one tael. This cup..." he shook his head repeatedly, the implication being that it was worth three taels at most.
 
-　　这几个顿时如冰水淋头一般，面面相睽，原来穿越必杀商品——玻璃杯不值钱啊……
+The few of them were instantly as if doused with ice water, looking at each other in dismay. It turned out that the ultimate transmigration product—the glass cup—was not valuable...
 
-　　[萧子山][y001]见这生意要谈不下去了，料想自己这边的估计有误，便拱手道：“我等久居海外，贵处的行情并不知晓，还请高老爷赐教。”
+[Xiao Zishan][y001] saw that the deal was about to fall through. He figured that their own estimate was wrong, so he cupped his hands and said, "We have lived overseas for a long time and do not know the market conditions here. We ask Master Gao to enlighten us."
 
-　　高举想这是要我自己开价了，他思索片刻，给出了价钱：
+Gao Ju thought this meant they wanted him to name his own price. He pondered for a moment and gave his prices:
 
-　　粉盒，每个白银十两。
+Powder box, ten taels of silver each.
 
-　　玻璃杯，每个一两。
+Glass cup, one tael each.
 
-　　密胺的碗碟，大得五钱，小得二钱，勺子之类，一钱。
+Melamine bowls and dishes, five qian for large, two qian for small, spoons and the like, one qian.
 
-　　塑料饭盒，每个三两。
+Plastic lunch box, three taels each.
 
-　　塑料雨衣，每件一钱。
+Plastic raincoat, one qian each.
 
-　　小刀，每把五钱。
+Small knife, five qian each.
 
-　　传统穿越暴利神器玻璃杯，居然惨败！一千两成了一两，这个落差也是在太大了，钻石变成了玻璃。
+The traditional transmigration profit-making artifact, the glass cup, had suffered a crushing defeat! One thousand taels had become one tael. The drop was too great. A diamond had turned into glass.
 
-　　倒是不怎么起眼的塑料小粉盒，才对了明代商人的胃口，可见做生意到什么时候都不能想当然。[萧子山][y001]便问起这广州的海贸之事，顺便套问下对方对自己的商品的看法。
+On the other hand, the inconspicuous little plastic powder box was what appealed to the Ming Dynasty merchant. It was clear that one could not make assumptions in business at any time. [Xiao Zishan][y001] then asked about the maritime trade in Guangzhou, and at the same time tried to gauge the other party's opinion of his own goods.
 
-　　原来这广州城的海外贸易，是佛郎机人垄断的。不管哪里来的外商，泊船只能泊在濠镜澳，听候丈量抽税，然后才能发卖货物。能进入广州城进行贸易的只有佛郎机商人。城里有专营出口的三十六行，就是和他们做生意，每年都要订购大量的瓷器、生丝、白糖和其他各色货物。
+It turned out that the overseas trade in Guangzhou was monopolized by the Franks. No matter where the foreign merchants came from, their ships could only anchor in Macau, wait to be measured and taxed, and then they could sell their goods. Only Frankish merchants could enter Guangzhou city to trade. In the city, there were thirty-six guilds specializing in exports that did business with them, ordering large quantities of porcelain, raw silk, white sugar, and other various goods every year.
 
-　　不过高老爷这些濠畔街的商人则又是另外一个路数，这个路数，高老爷虽不明说，[萧子山][y001]也从后世的文献中读到过。
+However, merchants like Master Gao on Haopan Street had another way. Although Master Gao did not say it explicitly, [Xiao Zishan][y001] had read about it in later documents.
 
-　　高老爷最感兴趣的就是那粉盒里的镜子，他说这东西偶然也有佛郎机人贩来，大镜可价达数百两，他们的小镜子虽然小了点，却比泰西来的镜子清澈透亮得多。要是能有尺寸更大的，价钱好说。至于那“软瓷”——密胺的碗碟，论到质地手感花纹，都没什么出奇的，只是好在轻便不碎上。“软玻璃碗”，也就是塑料饭盒，虽然不碎，但是比起玻璃碗又不如它晶莹剔透。至于塑料雨衣和小刀，在高老爷看来不过是些玩物。
+Master Gao was most interested in the mirror in the powder box. He said that occasionally Franks would also sell these things. A large mirror could fetch a price of several hundred taels. Although their small mirror was a bit smaller, it was much clearer and brighter than the mirrors from the West. If there were larger sizes, the price would be negotiable. As for the "soft porcelain"—the melamine bowls and dishes—in terms of texture, feel, and pattern, there was nothing special about them, but they were good for being light and unbreakable. The "soft glass bowls," that is, the plastic lunch boxes, although unbreakable, were not as crystal clear as glass bowls. As for the plastic raincoats and small knives, in Master Gao's eyes, they were just some toys.
 
-　　众人汗颜：即使我们自豪的多出几百年的见识，也未必胜得过人家。
+The group was ashamed: even with our proud hundreds of years of advanced knowledge, we may not be better than others.
 
-　　言谈里高老爷也多方试探，问及澳洲的风土人情。[萧子山][y001]只是敷衍，只说本国尚蓝，国内多能工巧匠善，多奇巧之货，以工商立国，国人好空谈，每以名目自立一党，鼓吹言论。然乌合瓦聚，时日稍久自消解。问及国主何许人也，乃云国有一主，号为“八尺”，下有权相，掌军机民生事，号“小米”，国中无论贵贱，都拜服于神使名唤“啊大米”者。听得高老爷啧啧称奇。
+In the conversation, Master Gao also tried to probe in many ways, asking about the customs and conditions of Australia. [Xiao Zishan][y001] was just perfunctory, only saying that their country favored the color blue, that there were many skilled craftsmen in the country who were good at making strange and ingenious goods, that it was a nation founded on industry and commerce, and that the people were fond of empty talk, often forming their own factions under various names and promoting their own opinions. But they were a disorderly mob, and would dissolve on their own after a short time. When asked who the ruler of the country was, he said that the country had a ruler, called "Bachi" (Eight Chi), and under him was a powerful prime minister who was in charge of military and civil affairs, called "Xiaomi" (Little Millet). And that everyone in the country, regardless of their status, all bowed down to a divine messenger named "A-Da-Mi" (Ah, Big Rice). Master Gao listened with clicks of his tongue in amazement.
 
-　　一路说来，三人早把不要喝茶的警惕忘得干干净净，起身告辞的时候，连茶汁都饮干了。这使高举高大老爷在心里鄙视了他们一把。行前便谈妥了交易，“澳洲海商”们三天后供应第一批货物，还承诺多带一些新奇之物过来。
+As they talked, the three of them had long since forgotten their vigilance about not drinking the tea. When they got up to leave, they had even drunk the tea dregs. This made Master Gao despise them in his heart. Before they left, they had settled the deal. The "Australian sea merchants" would supply the first batch of goods in three days, and also promised to bring more novelties.
 
-　　只是三人的离去让高老爷心里又犯了很大的嘀咕：这三个人不肯从大门出去，非要到后院的一所僻静之处，还得人都离开。高老爷不放心，派了个胆大心细的家丁从远处看着：见三个人鬼鬼祟祟地望了四周一阵，忽然转到墙后角落里，待家丁赶上去察看，已经廖然无踪了。
+Only, the departure of the three made Master Gao very suspicious again: these three people refused to go out the main gate, insisting on going to a secluded place in the backyard, and also wanted everyone to leave. Master Gao was not at ease and sent a bold and meticulous servant to watch from a distance: he saw the three people look around furtively for a while, then suddenly turn into a corner behind a wall. By the time the servant rushed up to check, they were gone without a trace.
 
-　　【注：玻璃器的价格，来自王世贞的《凤洲杂编》，原价格单位为贯。这是嘉靖年的价格，但是我查不到17世纪的价格，暂时就用它代替一下，诸位不用深究。如有知道的，也请赐教。】
+[Note: The price of glassware comes from Wang Shizhen's "Miscellaneous Records of Fengzhou." The original price unit was the guan. This was the price in the Jiajing era, but I could not find the price for the 17th century, so I am using it as a substitute for now. Please do not delve too deeply into it. If you know, please enlighten me.]
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
