--- a/_posts/2009-9-9-1-00900.md
+++ b/_posts/2009-9-9-1-00900.md
@@ -1,72 +1,73 @@
 ---
 layout: post
-title: 第九节 新社会与旧社会
+title: "Section 9: The New Society and the Old Society"
 category: 1
 path: 2009-9-9-1-00900.md
 tag: [normal]
 ---
 
-　　网络上的讨论既有对穿越本身的准备工作的，也对未来穿越政策的：包括组织形式、军事架构、工业、农业、教育、政权组织等等。
+The online discussions covered both the preparations for the transmigration itself and the future policies of the new world: including organizational structure, military framework, industry, agriculture, education, political organization, and so on.
 
-　　每天讨论群的留言版内都会有大量的更新，报名参加穿越行动的人士，可以随时进行同步的讨论。
+Every day, the message board of the discussion group would be filled with a large number of updates. Those who signed up for the transmigration operation could participate in synchronous discussions at any time.
 
-　　议会民主？三权分立？君主立宪？集权主义？民族主义？社会主义？
+Parliamentary democracy? Separation of powers? Constitutional monarchy? Totalitarianism? Nationalism? Socialism?
 
-　　人人都想当新世界的理论家。
+Everyone wanted to be the theorist of the new world.
 
-　　讨论非常的热烈，各种观点和意见层出不穷。做一个历史的纂改者去窃明篡清是许多人的梦想。但是要建立起一个什么样的新世界，显然是见仁见智的事情。从搞民主还是独裁，和平还是军国，议会还是集权……一直到服装的款式，要不要推行全民义务教育，军队用什么语言喊操，甚至爵位制度，都有人在争论，一时口水与谩骂齐飞，帽子与棍子同色。
+The discussions were extremely heated, with all sorts of viewpoints and opinions emerging one after another. To be a tamperer of history, to usurp the Ming and overthrow the Qing, was the dream of many. But what kind of new world to build was clearly a matter of differing opinions. From democracy versus dictatorship, peace versus militarism, parliament versus centralism... all the way down to clothing styles, whether to implement universal compulsory education, what language the army should use for drills, and even the system of nobility, people were arguing about everything. For a time, saliva and curses flew together, and hats and clubs were of the same color.
 
-　　执委会对激烈的讨论抱着不参与，不评论的态度。既然大家愿意去吵，那就吵个不亦乐乎好了，现在吵，总比到了海南的沙滩上去吵好。而且人在网络上容易暴露出其本来面目，可以进一步的加深对这些人的了解，挑选合适的骨干人选。
+The Executive Committee adopted an attitude of non-participation and non-commentary towards the heated discussions. Since everyone was willing to argue, let them argue to their hearts' content. It was better to argue now than on the beaches of Hainan. Moreover, people tended to reveal their true colors online, which could further deepen the understanding of these people and help select suitable core personnel.
 
-　　很难说这个执委会是通过什么组织形式和选举原则建立起来的，它又凭什么来选择谁可以进入委员会。这在注重民主权力的现代人看来似乎是不可思议的。但是想来也没什么奇怪的：穿越者们在长达一年的准备期内并没有真正的开过一次全体大会，也从未选举过什么人担任职务。事实上，这也是不可能的——参与者始终是在变化中，某次会议上的活跃分子，也许下一次就不再出来了，然而又会有新的人要求加入。[萧子山][y001]一直试图统计出一个名单，差不多半年之后他才基本如愿。在人员构成不稳定的状态下，一直主持着穿越日常准备工作的[文德嗣][y002]、[萧子山][y001]和[王洛宾][y003]这三个人自然而然的成了执委会的核心。
+It is hard to say what organizational form and election principles the Executive Committee was established through, or on what basis it chose who could enter the committee. This might seem incredible to modern people who value democratic rights. But on second thought, it was not strange at all: the transmigrators had not held a single general meeting during the year-long preparation period, nor had they ever elected anyone to any position. In fact, this was also impossible—the participants were always in flux. An active member of one meeting might not show up for the next, yet new people would ask to join. [Xiao Zishan][y001] had been trying to compile a list, and it was only after almost half a year that he basically succeeded. In a state of unstable personnel, the three people who had been presiding over the daily preparations for the transmigration—[Wen Desi][y002], [Xiao Zishan][y001], and [Wang Luobin][y003]—naturally became the core of the Executive Committee.
 
-　　此时，他们并不急于扩大执委会。三人虽然出身、生活环境、学历、工作环境各不相同，却在很多方面能够彼此心领神会。有一些人要求立刻报到的时候，执委会没有讨论就异口同声的回答：目前的基础设施还没有完备，要再等一个阶段。他们心里很清楚，此时在自己手里积攒下的穿越资本越多，未来的穿越权力架构里他们的地位就越重要。
+At this time, they were in no hurry to expand the Executive Committee. Although the three of them came from different backgrounds, living environments, educational levels, and work environments, they could understand each other tacitly in many aspects. When some people demanded to report for duty immediately, the Executive Committee answered in unison without discussion: the infrastructure was not yet complete, and they had to wait for another stage. They knew very well in their hearts that the more transmigration capital they accumulated in their hands at this time, the more important their position would be in the future power structure of the transmigration.
 
-　　在[萧子山][y001]看来，无论在什么时候，资历永远是有价值的无形资产。特别这样的社会性组织内，资历长短往往决定了在组织中的发言权和威望的大小。现在他们对很多穿越者的状况了解有限，过早让他们加入会让某些人获得与本身能力不相配的资历，对以后的工作不利。
+In [Xiao Zishan][y001]'s view, seniority was always a valuable intangible asset, no matter the time. Especially in such a social organization, the length of one's seniority often determined the weight of one's voice and prestige in the organization. Right now, their understanding of the situation of many transmigrators was limited. Letting them join too early would give some people seniority that did not match their abilities, which would be detrimental to future work.
 
-　　[文德嗣][y002]的考虑则比较现实：这个时空里最不缺的就是浮躁而夸夸其谈的人——成事不足败事有余。过滤这些人的最佳方式就是用时间来消磨他们的一时冲动。
+[Wen Desi][y002]'s consideration was more practical: what this time-space did not lack were impetuous and boastful people—more than capable of ruining things, but not of accomplishing them. The best way to filter out these people was to use time to wear away their momentary impulse.
 
-　　当然，这个沉寂期不能过长。准备工作涉及太多的专业知识和技能，靠他们三个是无论如何也搞不定的，执委会需要新鲜血液。在开过一个小会之后，决定事不宜迟，马上再穿一次，搞到足够的钱以便进入实质性的准备工作。
+Of course, this period of silence could not be too long. The preparation work involved too much professional knowledge and skills, and it was impossible for the three of them to handle it all. The Executive Committee needed fresh blood. After a small meeting, they decided that it was not advisable to delay, and they would immediately cross over again to get enough money to enter the substantive preparation work.
 
-　　“我家老爷吩咐过了，几位老爷来了，就请先更衣。一会老爷就出来。”一个管事的恭恭敬敬的将他们迎入一座小院。
+"My master has given instructions. When you esteemed gentlemen arrive, please change your clothes first. The master will be out shortly." A manager respectfully welcomed them into a small courtyard.
 
-　　院子小巧精致，花木扶疏，很是雅静。案几上，放着几个木盘，衣巾鞋帽一应俱全。
+The courtyard was small and exquisite, with lush flowers and trees, very elegant and quiet. On the table were several wooden trays with a complete set of clothes, towels, shoes, and hats.
 
-　　[文德嗣][y002]他们还不知道高老爷把连镜粉盒连同一些稀奇物件馈送了十多家素有来往的达官显贵，立马就轰动了整个广州城。玻璃镜子，别说老百姓，就是一般的有钱人，也是听说得多，见过得少。更不用说这盒子本身更是闻所未闻。他铺面上的求购者络绎不绝。十两一个的粉盒，转手就卖到了五十两，还被一抢而空。
+[Wen Desi][y002] and the others did not yet know that Master Gao had gifted the powder boxes with mirrors, along with some other strange objects, to more than ten high-ranking officials and dignitaries with whom he had dealings, which immediately caused a sensation throughout Guangzhou. Glass mirrors, not to mention for the common people, even for the generally wealthy, were something they had heard of more than they had seen. Not to mention that the box itself was something unheard of. The number of buyers at his shop was endless. A powder box that cost ten taels was resold for fifty taels and was still snatched up in an instant.
 
-　　高老爷贩卖番货二十多年，虽然也挣到了一个不小的局面，这么露脸的事情却还是第一遭。最近半个月来拜访他的同行真是应了把门槛踩穿的俗话了。每家都想从他嘴里套出货是从哪里来的。这帮子做老了海贸的商人，自然知道不管是佛郎机、红毛还是英吉利商人，都没这种货色，最近也不是他们来船的船期。
+Master Gao had been dealing in foreign goods for more than twenty years. Although he had built up a considerable business, this was the first time he had been in the limelight like this. In the past half month, the number of colleagues who had visited him truly lived up to the saying of wearing out the threshold. Every one of them wanted to get out of his mouth where the goods came from. This group of merchants, who were old hands at maritime trade, naturally knew that neither the Franks, the Red Hairs, nor the English merchants had this kind of goods, and it was not their shipping season either.
 
-　　最大的可能，就是广州来了新的海外客商，而这海商就给高老爷接去了。在很多人后悔自己的耳目怎么如此闭塞的时候，在高宅和铺子附近徘徊的可疑人物也多了许多。这让高老爷产生了警觉，虽说他有杨公公做靠山，但这广州城里吃海通洋的人物，哪个也不是好惹的。眼下小心了许多，[文德嗣][y002]托付的买房子的事情也暂时放下了。
+The biggest possibility was that a new overseas merchant had come to Guangzhou, and this sea merchant had been taken in by Master Gao. While many people were regretting how their own ears and eyes had been so closed, the number of suspicious characters loitering around the Gao residence and shop also increased. This made Master Gao vigilant. Although he had Eunuch Yang as a backer, none of the figures in Guangzhou who dealt in sea trade were to be trifled with. For now, he was much more careful, and had temporarily put aside the matter of buying a house that [Wen Desi][y002] had entrusted to him.
 
-　　此时高举已经顾不上这几个人的可疑之处了。商人最大特性就是逐利。他最担心的反而是澳洲海商的模样过于醒目，才做了这一番安排。他不想让人知晓了自己的货源底细——这笔天大的富贵，一定要要牢牢的掌握在自己手里。
+At this moment, Gao Ju could no longer be bothered with the suspicious aspects of these people. The greatest characteristic of a merchant is the pursuit of profit. What he was most worried about, on the contrary, was that the appearance of the Australian sea merchants was too conspicuous, which was why he had made these arrangements. He did not want people to know the details of his source of goods—this huge fortune must be firmly held in his own hands.
 
-　　[文德嗣][y002]和[王洛宾][y003]对视一眼，大致也猜得出高老爷打什么主意。不过不引人注目倒是合乎他们的心意。当下换了衣服。
+[Wen Desi][y002] and [Wang Luobin][y003] exchanged a glance, and they could roughly guess what Master Gao was up to. However, not attracting attention was in line with their wishes. So they changed their clothes.
 
-　　只是这明代的衣冠，到底该怎么穿，实在摸不着头脑，这几位又不是汉服爱好者，折腾了半天，好歹算是穿上了。外面的管事进来送茶，见巾歪领斜的实在太过狼狈，只好唤来个丫鬟服侍更衣。
+Only, how to wear the clothes of the Ming Dynasty, they really had no idea. These men were not Hanfu enthusiasts. After a long struggle, they finally managed to put them on. The manager from outside came in to serve tea. Seeing their disheveled appearance with crooked scarves and slanted collars, he had no choice but to call a maid to help them dress.
 
-　　广东豪门富家都素有蓄婢的风气，管事的也知道这几位客商是老爷刻意要交好的，唤来的婢女也自然不差。二个都是明眸善睐的十五六少女，娇俏可人，进来落落大方的福了一福，上来为他们脱卸那穿戴得不成模样的衣服。[文总][y002]也算是经过些风月场面的人物，给这样的萝莉柔软的小手扶着揉弄，宽衣解带的，也有些吃不消，心想这才是男人的天堂啊！
+The wealthy families of Guangdong had a custom of keeping maids. The manager also knew that these merchants were guests the master deliberately wanted to befriend, so the maids he called were naturally not bad. Both were fifteen or sixteen-year-old girls with bright eyes and good looks, charming and lovely. They came in, curtsied gracefully, and came forward to help them take off the clothes they had put on so clumsily. [Chief Wen][y002] considered himself a man who had seen some of the world, but being helped by the soft little hands of such lolis, having his clothes loosened and his belt untied, he was a bit overwhelmed. He thought to himself, *this is a man's paradise!*.
 
-　　正胡思乱想间，瞥见[萧子山][y001]也一脸神往。便低声笑道：
+As his thoughts were wandering, he caught a glimpse of [Xiao Zishan][y001] also looking entranced. He laughed in a low voice:
 
-　　“怎么，你也动心了？”
+"What, are you tempted too?"
 
-　　“是啊，这才是男人应该过得日子。”[萧子山][y001]想起了当年的女朋友那种跋扈劲：封建社会也有光明的一面嘛。
+"Yes, this is the life a man should live." [Xiao Zishan][y001] thought of the domineering attitude of his ex-girlfriend: feudal society has its bright side too.
 
-　　“怎么不是！”[王洛宾][y003]也愤愤然，“现代社会就是礼崩乐坏。”说着控诉起他那体育系毕业的老婆是如何如何如何，愤懑之情溢于言表，让[萧子山][y001]和[文德嗣][y002]充分了解了其老婆的威力。
+"You bet!" [Wang Luobin][y003] also said indignantly. "Modern society is just a collapse of rites and music." He then went on to complain about how his wife, a graduate of the physical education department, was so and so, his resentment overflowing in his words, giving [Xiao Zishan][y001] and [Wen Desi][y002] a full understanding of the power of his wife.
 
-　　两个垂鬟侍儿站在一旁，见[王洛宾][y003]说个不停，但是又听不太懂，只是看他满脸激昂还不住的指手画脚，刚戴正的巾又歪了过去，耷拉在脑门上，都低着头抿着嘴唇笑。
+The two maids with their hair in buns stood aside. Seeing [Wang Luobin][y003] talking non-stop, but not understanding much of it, they just saw his face full of passion and his constant gesturing. The scarf he had just put on straight had gone crooked again, dangling on his forehead. They both lowered their heads and pursed their lips to keep from laughing.
 
-　　[萧子山][y001]捅了一下慷慨激昂的[王洛宾][y003]：“[王工][y003]，你看这小丫头怎么样？和高老爷说一声，带回去吧？”
+[Xiao Zishan][y001] nudged the impassioned [Wang Luobin][y003]: "[Engineer Wang][y003], what do you think of this little maid? Should we ask Master Gao to let you take her back?"
 
-　　[王洛宾][y003]连连摇头：“初中生啊，我怎么下得了手！”
+[Wang Luobin][y003] shook his head repeatedly: "She's a junior high school student! How could I lay a hand on her!"
 
-　　“高中生你就下得了手了？”[萧子山][y001]继续打趣他，“先养着，过几年不就熟了……”
+"So you could if she were a high school student?" [Xiao Zishan][y001] continued to tease him. "Just raise her for a few years, and she'll be ripe..."
 
-　　“还搞萝莉养成计划？”[文德嗣][y002]插了进来，“我倒是蛮有兴趣。”说着把女孩子上上下下地打量了个遍：这二个女孩子虽然略嫌瘦小，但是还算白净，容貌清秀，如果加强点营养，是个好胚子……
+"Planning a loli-raising simulation?" [Wen Desi][y002] chimed in. "I'm quite interested." He then looked the girls up and down: although these two girls were a bit thin and small, they were fair-skinned and had delicate features. If they were given a bit more nutrition, they would be good material...
 
-　　大灰狼的眼睛在小白兔身上转悠的时候，帘子一挑，高老爷昂然而入，见此情景，不由微微一笑。这帮子海商出入风浪都是经年累月的，上得岸来，个个都是色中饿鬼。那些红毛佛郎机人就更不用说——什么样的女人都要。
+As the big gray wolves' eyes were roaming over the little white rabbits, the curtain was lifted, and Master Gao entered with a dignified air. Seeing this scene, he couldn't help but smile slightly. This group of sea merchants had been through wind and waves for years. When they came ashore, every one of them was a starved ghost for sex. Not to mention those Red Hairs and Franks—they would take any kind of woman.
 
-　　却不多言，只拱手作揖道：“几位贵客，一向安好？”
+But he didn't say much, just cupped his hands in a salute and said, "Esteemed guests, have you been well?"
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
