--- a/_posts/2009-10-10-1-04000.md
+++ b/_posts/2009-10-10-1-04000.md
@@ -1,181 +1,183 @@
 ---
 layout: post
-title: 第四十节 人事
+title: "Section 40: Personnel"
 category: 1
 path: 2009-10-10-1-04000.md
 tag: [normal]
 ---
 
-　　“都安排下了，放在7号楼的106了。”[萧子山][y001]拿文件夹，装模作样地看了下，其实他不看都记得，这样只不过是因为常年当小白领开会留存下来的毛病。
+"They've all been settled in, placed in Room 106 of Building 7." [Xiao Zishan][y001] held a folder and pretended to look at it. In truth, he remembered without looking; it was just a habit from his years as a white-collar worker in meetings.
 
-　　“孟贤，二十五岁，出过国，擅长英语，学的是金融和会计。”
+"Meng Xian, twenty-five, has been abroad, fluent in English, studied finance and accounting."
 
-　　“潘锋，二十八岁，无业。自称当过快速消费品行业代表。单身。”
+"Pan Feng, twenty-eight, unemployed. Claims to have been a representative in the fast-moving consumer goods industry. Single."
 
-　　“查梧础，二十四岁，制药厂技术员。单身。”
+"Zha Wuchu, twenty-four, technician at a pharmaceutical factory. Single."
 
-　　“田九九，二十七，X省X市水利设计院，技术员，给排水专业。单身。”
+"Tian Jiujiu, twenty-seven, technician at the X City Water Conservancy Design Institute in X Province, specializing in water supply and drainage. Single."
 
-　　“好啊，除了一个废物之外，都是有用的专业人才。”魏爱文高兴的一拍桌子，故意扫了[萧子山][y001]一眼。
+"Great! Apart from one useless one, they are all useful professionals," Wei Aiwen said, slamming the table happily and deliberately glancing at [Xiao Zishan][y001].
 
-　　[萧子山][y001]当然知道他什么意思。从心里，他很鄙视这个咋咋呼呼的家伙。但是他从不把鄙视流露在脸上，也不和他当面争执什么。他很清楚，即使是打牌他也不属于这个屋子。
+Of course, [Xiao Zishan][y001] knew what he meant. In his heart, he despised this boisterous fellow. But he never let the contempt show on his face, nor did he argue with him openly. He knew very well that even at this card game, he didn't truly belong in this room.
 
-　　其他几个人只是默默的点了下头，[萧子山][y001]继续他的汇报：
+The others just nodded silently. [Xiao Zishan][y001] continued his report:
 
-　　“和他们都随便聊了一下，大家对穿越都很热情，态度也比较坚决。”
+"I had a casual chat with all of them. Everyone is very enthusiastic about the transmigration and their attitude is quite firm."
 
-　　所谓聊天，是执委会对新加入者的第一次审查，通过表达欢迎的聊天谈话形式，大致摸清来人的基本底细和性格。看其是否有足够的团队合作精神和良好的情商，适合加入到这次史无前例的大冒险中。
+This so-called chat was the Executive Committee's first screening of new members. Through a welcoming conversation, they could get a general idea of the newcomer's background and personality, to see if they had enough team spirit and good emotional intelligence to be suitable for this unprecedented adventure.
 
-　　“孟贤，极度喜爱轻兵器，在体校练过几年移动靶，言谈中对玩枪很有兴趣。”
+"Meng Xian is extremely fond of light weapons. He trained in moving target shooting at a sports school for a few years and showed great interest in firearms during our conversation."
 
-　　“潘锋，在整个过程中很少说话，性格比较内敛。爱好是园艺和文史，对快速消费品销业很了解。有会计上岗证。”
+"Pan Feng spoke very little throughout the process. He has a more reserved personality. His hobbies are gardening and literature, and he is very knowledgeable about the FMCG industry. He has an accountant certificate."
 
-　　“田九九……”
+"Tian Jiujiu..."
 
-　　简单介绍完了他对这些新人的印象和看法，[萧子山][y001]还同时向执委会提供了一张这些人登记的随身物品的清单。
+After briefly introducing his impressions and views on the newcomers, [Xiao Zishan][y001] also provided the Executive Committee with a list of the personal belongings they had registered.
 
-　　“我已经写一个基本的介绍，晚上和登记表一起交给内务组。由该组来进行下一步的评估和审查。已经安排一个人去和他们一起住。”
+"I have written a basic introduction, which will be submitted to the Internal Affairs Group tonight along with the registration forms. That group will conduct the next stage of assessment and review. Someone has already been arranged to live with them."
 
-　　“安排谁去？”[文德嗣][y002]发问。
+"Who was arranged to go?" [Wen Desi][y002] asked.
 
-　　“这个我不清楚了，以后的事情就归内务组管了。”[萧子山][y001]摊开手，“一会我问下？”
+"I'm not clear on that. Future matters are under the jurisdiction of the Internal Affairs Group," [Xiao Zishan][y001] said, spreading his hands. "Should I ask in a bit?"
 
-　　“不用了。”[文德嗣][y002]、[马千瞩][y005]、[萧子山][y001]的目光交集了一下。
+"No need." The gazes of [Wen Desi][y002], [Ma Qianzhu][y005], and [Xiao Zishan][y001] met for a moment.
 
-　　“这样的话，到目前为止，有效报到476个。”
+"In that case, as of now, we have 476 effective check-ins."
 
-　　从半年前开始人员集中，差不多每周都有人来到这里。他们都经历了孟贤他们同样的流程。
+Since the personnel began gathering six months ago, people had been arriving almost every week. They all went through the same process as Meng Xian and his group.
 
-　　当初在帖子里热烈讨论回贴准备穿越虫洞的2106人中，有不到800人参加了随后的SkyPe聊天群。真正来这里，并且留下的，不到500人。
+Of the 2,106 people who had enthusiastically discussed and replied to the posts about transmigrating through the wormhole, fewer than 800 had joined the subsequent Skype chat group. And of those, fewer than 500 had actually come here and stayed.
 
-　　“走得人多吗？”
+"Have many people left?"
 
-　　“前后大概有50来个吧。这476个是目前决心参加的穿越的。”[萧子山][y001]看了下名单，“未来二周应该还会有50人左右。这些人应该都会来。”
+"About 50 or so, in total. These 476 are the ones currently determined to participate in the transmigration." [Xiao Zishan][y001] looked at the list. "There should be about 50 more people arriving in the next two weeks. These ones should all come."
 
-　　“千贵会变成五百人院了，”魏爱文感慨起来，“人太少了，说的时候都是气冲斗牛，要真干了全TMD成了胆小鬼！”
+"The 'Thousand Nobles' will become the 'Five Hundred Man Council'," Wei Aiwen lamented. "Too few people. When it was just talk, they were all full of fighting spirit. When it's time for action, they all turn into damn cowards!"
 
-　　其他几个人都不作声。人多好还是人少好，这是个悖论。对于这几位占据着执行委员会职务的人来说，人少似乎更有利一些。人多了，心也就多了。说到底，虽然这一切筹备计划都是执委会在负责，但是毕竟没经过群众的意见。群众此时都服从执委会的安排，只不过是因为初到一个陌生地方之后的盲从而已。等这群人都混熟了，保不定要出什么妖蛾子。
+The others remained silent. Whether more people were better or fewer people were better was a paradox. For these members of the Executive Committee, fewer people seemed more advantageous. More people meant more minds, more opinions. In the end, although the Executive Committee was responsible for all the preparations, they hadn't really consulted the masses. The masses were currently obeying the committee's arrangements, but that was just the blind compliance that comes with arriving in a strange new place. Once this group of people became familiar with each other, there was no telling what kind of trouble they might stir up.
 
-　　“队伍精干些好。”[马千瞩][y005]打着哈哈。
+"It's better to have a lean and capable team," [Ma Qianzhu][y005] said, trying to smooth things over.
 
-　　“说起来我们倒是各方面人才都有，什么都不缺。”[萧子山][y001]比较满意的说，“就是女生少一些。多半都是陪丈夫或者男友一起穿的，单身的不多。”
+"Speaking of which, we do have talent in all areas. We're not lacking anything," [Xiao Zishan][y001] said with some satisfaction. "It's just that there are fewer girls. Most of them are accompanying their husbands or boyfriends. Not many are single."
 
-　　“这个自然了，来得基本都是光棍。”[文德嗣][y002]仰起了下脖子，“有家有口的谁还跑来干这个……”
+"That's natural. Most of the people who come are bachelors," [Wen Desi][y002] said, tilting his head back. "Who with a family would come here to do this..."
 
-　　魏爱文说：“女人就是个麻烦，一天到晚哼哼唧唧的。”
+Wei Aiwen said, "Women are just trouble, whining and complaining all day long."
 
-　　“那你以后可别向组织要老婆。咱们不管这事。”
+"Then don't you dare ask the organization for a wife in the future. We're not in charge of that."
 
-　　“老子才不稀罕，古代的小罗莉，老子要多少有多少，一个给老子捶背，一个给老子捏腰，还有一个……”
+"Like I care! Ancient lolis, I can have as many as I want. One to massage my back, one to rub my waist, and another one..."
 
-　　席亚洲不耐烦的打断了他的话：“老子的老子的，你一个P孩，张口闭口老子，就这德性什么女人也看不上你！”
+Xi Yazhou interrupted him impatiently, "'I', 'I', 'I'. You're just a kid, and you keep talking like you're the boss. With that attitude, no woman would ever be interested in you!"
 
-　　“没关系，小魏，大明的背背山很发达的，而且都是高素质人才才玩……”
+"It's okay, Little Wei. Brokeback Mountain was very developed in the Ming Dynasty, and it was only played by high-quality talent..."
 
-　　“扯淡，你才背背山呢，你们全家都背背山！”小伙子发火了，这里调侃他已经成了一种习惯了。
+"Bullshit! You're the one who's Brokeback Mountain! Your whole family is Brokeback Mountain!" the young man flared up. Teasing him had become a habit here.
 
-　　“对了，我有个问题想请示下执委会，”[萧子山][y001]说，“关于外国人的。”
+"By the way, I have a question for the Executive Committee," [Xiao Zishan][y001] said. "It's about foreigners."
 
-　　“外国人？不要！以后麻烦的很！”
+"Foreigners? No! They'll be a lot of trouble later on!"
 
-　　“我也反对外国人。非我族类，其心必异！”
+"I also oppose foreigners. Those not of our race are bound to have different hearts!"
 
-　　“这个比较特殊。”[萧子山][y001]继续说。
+"This one is rather special," [Xiao Zishan][y001] continued.
 
-　　“你别说是个参加过伊拉克战争的军医。要是的话可以考虑考虑。”
+"Don't tell me it's a military doctor who served in the Iraq War. If so, we can consider it."
 
-　　“不是……是某位报名者的女朋友。”[萧子山][y001]从文件夹里抽出一张纸，念了起来，“丁丁，男，32岁，汉族，某大型传媒集团记者。这个洋妞叫潘潘？好像是美国人。”
+"No... it's the girlfriend of one of the applicants." [Xiao Zishan][y001] pulled a piece of paper from his folder and began to read. "Ding Ding, male, 32, Han Chinese, reporter for a large media group. This foreign girl is called Panpan? Seems to be an American."
 
-　　“靠，大洋马啊。”魏爱文的脑袋凑了上来，“有照片没有，有照片没有？”
+"Damn, a Western chick!" Wei Aiwen's head popped over. "Are there photos? Are there photos?"
 
-　　“人的女朋友，你起什么劲。一边呆着。”
+"She's someone's girlfriend, what are you getting so excited about? Stay on the side."
 
-　　“要审查！说不定是美国特务。”魏爱文手舞足蹈，“肯定受FBI指示打入我们内部的，免得我们改写历史！”
+"We must investigate! She might be an American spy," Wei Aiwen gesticulated wildly. "She must have been sent by the FBI to infiltrate us, to prevent us from rewriting history!"
 
-　　“小魏啊，你知道FBI干什么的么？”百事通[罗铎][y011]来提醒他的技术性错误了。
+"Little Wei, do you even know what the FBI does?" the know-it-all [Luo Duo][y011] chimed in to correct his technical error.
 
-　　“反正就一个美国特务组织，还管保卫总统！”
+"Whatever, it's an American spy organization. They also protect the president!"
 
-　　“是不是要让你审查一番？”
+"Should we let you investigate her?"
 
-　　“我一定完成组织交给我的任务！”小伙子态度诚恳又坚决的保证着。开他玩笑的种利时看他认真的模样也不好意识继续调侃他了。
+"I will definitely complete the mission assigned to me by the organization!" the young man pledged with a sincere and resolute attitude. Zhong Lishi, who had been joking with him, saw his serious expression and felt a bit embarrassed to continue teasing him.
 
-　　[文德嗣][y002]点点头：“我个人同意，毕竟是人的家属，想去就带上吧。她就算想去效忠米利坚也没地方去效忠。”
+[Wen Desi][y002] nodded. "I personally agree. After all, she is a family member. If she wants to go, let's take her. Even if she wanted to be loyal to the United States, there would be no place for her to do so."
 
-　　“好吧。我和他确认一下，说起来我们还没有文宣传媒方面的人，将来是比较有用的人才”
+"Alright. I'll confirm with him. Speaking of which, we don't have anyone from the media and propaganda field yet. He could be a useful talent in the future."
 
-　　“我们什么专业的人才都需要，不是人才的普通人也要。”[文德嗣][y002]强调着，“接待报到的时候千万要注意，不要对有专业的人就热烈一些，没有专业的人就冷淡。这样不好。”
+"We need talent in every profession, and we also need ordinary people who aren't 'talent'," [Wen Desi][y002] emphasized. "When receiving new arrivals, we must be careful not to be warmer to those with professional skills and colder to those without. That's not good."
 
-　　“这个我明白，要有利于团结。”
+"I understand that. It's about promoting unity."
 
-　　孟贤躺在宿舍的铁架床上，望着搁在上铺的大行李包。外面安静极了，可以清晰地听到楼上某个家伙在看的A片的声响。
+***
 
-　　一路上的满腔热情，一旦安静下来，却为一种无法遣散的惶恐所占据。
+Meng Xian lay on the iron-framed bed in the dormitory, staring at the large luggage bag on the top bunk. It was extremely quiet outside. He could clearly hear the sounds of a porn movie someone was watching upstairs.
 
-　　我是怎么了……是发疯了么？好好米国工作不干，跑到这个广东的农村来，我到底想干什么？
+The enthusiasm he had felt all the way here, once the quiet set in, was replaced by an unshakable sense of panic.
 
-　　改变命运？再造历史？
+*What's wrong with me... have I gone mad? I quit a good job in the US to come to this rural part of Guangdong. What on earth am I trying to do?*
 
-　　孟贤平时也爱看架空YY小说，也幻想过穿越到另一个时空再造华夏、建功立业外加三妻四妾，但他知道这不过是小说而已。
+Change my destiny? Remake history?
 
-　　一旦穿越了虫洞，他就从这个世界上消失了，等于是死了。
+Meng Xian enjoyed reading alternate history fanfiction and had fantasized about transmigrating to another time to rebuild China, achieve great things, and have three wives and four concubines. But he knew that was just fiction.
 
-　　父母、亲戚、朋友，还有将来的老婆……当然，他现在还没有女朋友，更谈不上老婆。但是！如果不来这里，那么一个还不错的老婆是应该是有的……
+Once he passed through the wormhole, he would disappear from this world. It was the same as dying.
 
-　　想到这一瞬间，孟贤几乎产生了退出的冲动，他猛得坐了起来。看到临床的叶雨茗也在那里发呆。他比他们早住进宿舍。
+Parents, relatives, friends, and a future wife... Of course, he didn't have a girlfriend now, let alone a wife. But! If he hadn't come here, he probably could have had a decent wife...
 
-　　“怎么，睡不着啊。”看到他坐了起来，叶雨茗丢了一根烟过来。
+At that moment, Meng Xian almost had the urge to quit. He sat up abruptly. He saw his roommate, Ye Yuming, also staring blankly. He had moved into the dorm before them.
 
-　　“我不抽烟……”
+"What, can't sleep?" Seeing him sit up, Ye Yuming tossed him a cigarette.
 
-　　“那算了，我也不抽了，怎么，不去上网玩？”
+"I don't smoke..."
 
-　　“提不起精神来。”孟贤叹了口气，“不知道什么时候才会出发。”这话虽然有点违心，但也不乏真实的想法——真得穿了，反倒也死心了。这样的两难才最难受。
+"Alright then, I won't either. What's up, not going online to play?"
 
-　　“你真这么期待D日到来？”
+"Don't have the energy," Meng Xian sighed. "I don't know when we'll be leaving." Although the words were somewhat insincere, they also contained a grain of truth—if they had already transmigrated, he would have resigned himself to his fate. This dilemma was the most unbearable.
 
-　　“你不是？”
+"Are you really looking forward to D-Day that much?"
 
-　　“不好说……觉得不靠谱。”叶雨茗闻了闻香烟，“要不是[文总][y002]、[马公][y005]都是我信任的人，加上……”他顿了下，“我还真有点怕是骗局。”
+"Aren't you?"
 
-　　“应该不会吧。”孟贤的信心有点动摇了。
+"Hard to say... it feels unreliable." Ye Yuming sniffed the cigarette. "If it weren't for the fact that [Director Wen][y002] and [Director Ma][y005] are people I trust, plus..." He paused. "I'd be a little afraid it's a scam."
 
-　　“嗯，我想也不会。所以才来了嘛，不过，过去会怎么样，还真难说。”
+"It shouldn't be, right?" Meng Xian's confidence wavered a little.
 
-　　“[文总][y002]不是已经带人过去过了好多次吗？”
+"Yeah, I don't think so either. That's why I came. But, what will happen when we get there, it's really hard to say."
 
-　　“可毕竟有这么多人，还有东西。万一能量爆炸了怎么办？再或者，穿过去了出了什么事故……”叶雨茗的脸色很凝重，“把小命挂了可没得LOAD。”
+"Hasn't [Director Wen][y002] already taken people there many times?"
 
-　　“说不定在本位面又复活了呢。”一直在边上看书的潘锋忽然插了一句。
+"But there are so many of us, and all our stuff. What if the energy explodes? Or what if there's some accident after we transmigrate..." Ye Yuming's expression was grave. "If you lose your life, there's no 'LOAD' game."
 
-　　“哈哈，真有你的。”叶雨茗和孟贤都笑了起来。
+"Maybe you'll be resurrected in this dimension," Pan Feng, who had been reading a book on the side, suddenly interjected.
 
-　　潘锋丢了下书，爬了起来：“按穿越的一般套路，不都是被雷劈，被车撞，被水淹吗？所以在异时空挂了的话，也应该是在本时空复活吧。”
+"Haha, you're something else." Both Ye Yuming and Meng Xian laughed.
 
-　　“要是有时空管理局的话，你挂了以后马上去申请复活。”孟贤笑了一阵，心里稍微松快点，“小潘，你说你是干销售，卖什么的？”
+Pan Feng tossed his book aside and sat up. "According to the usual transmigration tropes, don't people get struck by lightning, hit by a car, or drown? So if you die in the other dimension, you should be resurrected in this one, right?"
 
-　　“我啊，不怕你们笑话，干最长的销售经历是卖卫生巾。”
+"If there's a Time-Space Administration Bureau, you can apply for resurrection right after you die." Meng Xian laughed for a while, feeling a little more relaxed. "Little Pan, you said you were in sales. What did you sell?"
 
-　　宿舍里的几个人都大笑起来。查梧础拍着床沿，笑着说：“你就瞎掰吧，你卖卫生巾？哪个妞来买啊……”
+"Me? You guys won't laugh, but my longest sales experience was selling sanitary napkins."
 
-　　潘锋拿起孟贤丢一边的烟：“我抽一支不介意吧。”
+The whole dorm burst into laughter. Zha Wuchu slapped the bed frame, laughing, "You're just making that up! You sold sanitary napkins? Which girl would buy from you..."
 
-　　“抽吧抽吧。”叶雨茗还给他点上了火，自己也来了一支。
+Pan Feng picked up the cigarette Meng Xian had tossed aside. "I'll smoke one if you don't mind."
 
-　　潘锋吸了一口：“咱做的是渠道销售，直接卖给批发商的。和小妞没关系……这年头快销越来越难，竞争对手越来越多，客户越来越拽，公司要求越来越高，就工资一百年不变……”
+"Go ahead, go ahead." Ye Yuming even lit it for him and took one for himself.
 
-　　“你觉得这事靠谱不？”叶雨茗追着问。
+Pan Feng took a drag. "I did channel sales, selling directly to wholesalers. It had nothing to do with girls... FMCG is getting harder and harder these days. More and more competitors, more and more arrogant customers, higher and higher demands from the company, but the salary never changes..."
 
-　　潘锋看了一眼他，嘴角露出点笑意来。
+"Do you think this whole thing is reliable?" Ye Yuming pressed.
 
-　　“为什么不靠谱？除非[文总][y002]是得了精神病，不然他搞这些干嘛？骗钱么？那他的这个规模大得要自己倒贴了。”
+Pan Feng glanced at him, a slight smile playing on his lips.
 
-　　“那你真得想穿？”叶雨茗紧接着问了一句。
+"Why wouldn't it be? Unless [Director Wen][y002] has gone insane, why would he be doing all this? To scam people out of money? The scale of this operation is so large he'd have to be paying out of his own pocket."
 
-　　“穿，为什么不穿？”潘锋弹了下烟灰，“咱是穷忙族。读过大学，上班也不算不卖力，做了这么多年，辛辛苦苦的干活也就能赚点小钱，还得存点防着生病，结个婚买了房子当房奴——你要抱怨几句吧，还有人为了拿几毛钱要你去游太平洋。”他笑了笑，“兄弟们知道啥叫铤而走险吗？咱胆子小，从小是良民，本时空里不敢干那违法乱纪的事情，可是活得又郁闷，所以就来铤而走险了。”
+"So you really want to transmigrate?" Ye Yuming asked immediately.
 
-　　宿舍里沉默了，这些话大概打动了每个人心里的某些东西。叶雨茗微微地笑了下，躺下来开始打给内务组的腹稿。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
+"Transmigrate, why not?" Pan Feng flicked his ash. "I'm one of the 'working poor.' I went to university, I work hard, but after all these years, all I can earn is a little money. I have to save some in case I get sick, and if I get married and buy a house, I become a mortgage slave. And if you complain, there are people who will tell you to go swim across the Pacific for a few cents." He smiled. "Brothers, do you know what it means to take a desperate risk? I'm timid, a law-abiding citizen since I was a kid. I don't dare to do anything illegal in this world, but life is frustrating. So, I came here to take a desperate risk."
+
+The dormitory fell silent. His words had probably struck a chord in everyone's heart. Ye Yuming smiled faintly, lay down, and began to mentally compose his report for the Internal Affairs Group.
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma Qianzhu"
 [y011]: /characters/y011 "罗铎"
