--- a/_posts/2009-10-14-1-04400.md
+++ b/_posts/2009-10-14-1-04400.md
@@ -1,103 +1,103 @@
 ---
 layout: post
-title: 第四十四节 核心问题
+title: "Section 44: The Core Issues"
 category: 1
 path: 2009-10-14-1-04400.md
 tag: [normal]
 ---
 
-　　“不统一思想，没有一个正确的指导方向。穿越之后的失败是必然的！”杜雯的声音穿过秋天的暮色，直入天高云淡的万里夜空。
+"Without unifying our thoughts, without a correct guiding direction, failure after the transmigration is inevitable!" Du Wen's voice cut through the autumn twilight, soaring straight into the vast, clear night sky.
 
-　　在围绕着操场转圈子的人一群人当中，没有一个人吭气。在操场上打球玩羽毛球的人穿越众不少，眼睛尖的人已经发觉了，这群绕场散步的人都是执委会的五六名主要委员，还有几个他们不太熟悉的人——这些人是目前尚未公开的政策资询小组的成员，以历史、法学、社会学专业为主的人士组成。青年历史学家于鄂水是组长，副组长则是杜雯女士。
+Among the group of people circling the athletic field, no one said a word. There were quite a few transmigrators playing basketball and badminton on the field, and the sharp-eyed ones had already noticed that this group walking around the track consisted of the five or six main members of the Executive Committee, along with a few others they didn't recognize—these were the members of the currently undisclosed Policy Advisory Group, composed mainly of individuals specializing in history, law, and sociology. The young historian Yu E'shui was the group leader, and the deputy leader was Ms. Du Wen.
 
-　　“统一什么思想？”良久，[马千瞩][y005]才说了这么一句，“大家会买你的账么？”
+"Unify what thoughts?" After a long silence, [Ma Qianzhu][y005] finally spoke. "Will everyone even buy what you're selling?"
 
-　　“笑话，一个政治性组织居然连自己的政治目标都没有，思想都不能统一，还想去拯救中华民族？”
+"What a joke! A political organization that doesn't even have its own political goals, that can't even unify its thoughts, and you still want to save the Chinese nation?"
 
-　　“拯救中华民族？”[文德嗣][y002]说，“那这个就算最高理想吧。起码比共产主义容易实现一点。”
+"Save the Chinese nation?" said [Wen Desi][y002]. "Let's call that our ultimate ideal, then. At least it's a bit more achievable than communism."
 
-　　“现阶段目标就是搞腐化了吧？我要养萝莉——”
+"The goal at the current stage is probably corruption, right? I want to raise lolis—"
 
-　　男人们嘴角都露出了暧昧的笑容。
+An ambiguous smile appeared on the corners of the men's mouths.
 
-　　“低级趣味！小资产阶级的局限性暴露无遗，历史证明……”杜雯开始痛批。
+"Low-class taste! The limitations of the petty bourgeoisie are on full display. History has proven..." Du Wen began her critique.
 
-　　“我们不要扯远了。”青年历史学家于鄂水开始把话题扭转回来，“近期和远期政治目标之类眼下都不需要考虑，其实关键只有三点：权力架构、利益分配、行事底线。”
+"Let's not get sidetracked," the young historian Yu E'shui said, steering the topic back. "We don't need to consider short-term and long-term political goals right now. In fact, there are only three key points: the power structure, the distribution of benefits, and the bottom line of our conduct."
 
-　　“执委会目前运作的不是很好吗？以后再完善一下就是了。”[萧子山][y001]对这个问题显然并不感兴趣。
+"Isn't the Executive Committee functioning very well at the moment? We can just improve it later," [Xiao Zishan][y001] said, clearly not interested in this issue.
 
-　　“你这是行政至上主义。”[文德嗣][y002]说，“执委会只是一个行政机构，它并非权力机构。”
+"That's administrative supremacism," said [Wen Desi][y002]. "The Executive Committee is just an administrative body, not a body of power."
 
-　　“可是现在的执委会效率很高，要是搞一个全民大会的话，任何事情都得投票，那还能办得成什么事情？别看这里不少人每天上网就是骂民猪柿油的，以后他们搞起民猪柿油比谁都起劲，到时候不挖个厕所也得开几天会！”
+"But the current Executive Committee is very efficient. If we have a general assembly, everything will have to be voted on. What could we possibly get done then? Don't be fooled, many of the people here who curse democracy and freedom online every day will be more enthusiastic about practicing it than anyone else. When that time comes, we'll need to hold meetings for days just to dig a latrine!"
 
-　　“所以更得有。”[文德嗣][y002]承认执委会的效率的确不错，“但这样的状态迟早是要出问题的。等群众站出来索取他们的权力的时候，执政者就被动了。”
+"That's why we need it even more," [Wen Desi][y002] admitted that the Executive Committee was indeed efficient. "But this state of affairs will sooner or later cause problems. When the masses stand up to demand their power, the rulers will be in a passive position."
 
-　　与其到最后被迫接受民主要求，不如早早的就把还没明白过来的群众纳入对执政者有利的政体框架内。此时穿越众们还沉浸在准备工作的狂热气氛中，等穿越之后，一切稳定下来之后，难道大家就心里没自己的小算盘——谁愿意一辈子当个群众呢？
+Rather than being forced to accept democratic demands in the end, it was better to incorporate the still-unaware masses into a political framework favorable to the rulers from the start. At this moment, the transmigrators were still immersed in the fervent atmosphere of preparation. After the transmigration, when everything stabilized, wouldn't everyone have their own little schemes? Who would want to be one of the masses for their entire life?
 
-　　执委会成立伊始，虽然各个组的组长都是委员，实际却是[文德嗣][y002]、[王洛宾][y003]和[萧子山][y001]的三寡头掌握核心权力。当发现[马千瞩][y005]在整个准备过程中崭露头角，威望渐显的时候，执委会迅速的将其结合进决策层。对中国人来说耍弄政治手腕几乎是天生的本事，大伙心里都雪亮的很。眼下穿越者之间没有利益分配和利益冲突的问题。当作领导只意味着更多付出的时候，多数人还是乐于做酱油众的。
+From the beginning of the Executive Committee, although the leaders of each group were all committee members, the core power was actually held by the triumvirate of [Wen Desi][y002], [Wang Luobin][y003], and [Xiao Zishan][y001]. When they discovered that [Ma Qianzhu][y005] was emerging as a prominent figure with growing prestige during the preparation process, the committee quickly integrated him into the decision-making layer. For Chinese people, playing political games is almost a natural talent; everyone understood the situation clearly. For now, there were no issues of benefit distribution or conflict of interest among the transmigrators. When being a leader only meant more work, most people were happy to be passive followers.
 
-　　“我们的权力架构呢？代议制还是全体大会。”
+"What about our power structure? A representative system or a general assembly?"
 
-　　“显然是全体大会。”
+"Obviously, a general assembly."
 
-　　穿越者统共也就五百多人，坐一起二个篮球场也容纳下得了。代议涉及到选举制度问题，太复杂了，眼下宜简不宜繁。
+There were only about five hundred transmigrators in total; two basketball courts could accommodate them all. A representative system would involve the issue of an election system, which was too complicated. For now, simplicity was better than complexity.
 
-　　“未来参加我们的，嗯，土人的权力呢？这个你不能不考虑吧。”
+"What about the power of the, um, natives who join us in the future? You can't ignore that."
 
-　　“早期我们不需要考虑土人的权益问题。我们和土人的关系就是利用与镇压。”钟利时博士悠然说，他是一个红果果的实利主义分子，“他们肯合作的，干活征地买东西我们都给钱，不肯合作的，严厉镇压到他们肯合作为止。”
+"In the early stages, we don't need to consider the rights and interests of the natives. Our relationship with the natives will be one of utilization and suppression," Dr. Zhong Lishi said leisurely. He was a naked pragmatist. "For those who are willing to cooperate, we will pay them for their work, land acquisition, and goods. For those who are unwilling to cooperate, we will suppress them severely until they are willing to cooperate."
 
-　　“你这作为和日本鬼子有什么不一样？他们可是我们的同胞。”
+"How is that different from the Japanese devils? They are our compatriots."
 
-　　“人也得认你是同胞才行。我们这幅模样哪个土人会觉得我们是同胞？”
+"They have to recognize you as a compatriot first. With our appearance, which native would think we are their compatriots?"
 
-　　“在未来，肯定要考虑到参加我们的当地人的利益——就叫‘归化人’吧，适当给予政治权力是完全应该——没有长远的利益，人凭什么给你卖命？”于鄂水说。
+"In the future, we must certainly consider the interests of the local people who join us—let's call them 'naturalized people'. It is entirely appropriate to grant them political power. Without long-term benefits, why would people risk their lives for you?" Yu E'shui said.
 
-　　“融入政策吗？”[萧子山][y001]担心起来，“归化人未来会很多，即使代议制也会造成话语权旁落的问题。”
+"An integration policy?" [Xiao Zishan][y001] worried. "There will be many naturalized people in the future. Even with a representative system, it could lead to the problem of our voice being marginalized."
 
-　　“小资产阶级的一个特点就是害怕发动群众！只有发动群众才能有广泛的社会基础，我们才能够对抗腐朽落后的封建政权。你们倒好，就想着自己当老爷。我反对这样的讨论！”杜雯对大家如此赤裸裸的讨论如何控制权力压迫人民感到愤怒——更关键的是对她的发言彻底的绿坝化。
+"A characteristic of the petty bourgeoisie is the fear of mobilizing the masses! Only by mobilizing the masses can we have a broad social base, and only then can we fight against the corrupt and backward feudal regime. But you people are just thinking about becoming masters yourselves. I object to such a discussion!" Du Wen was furious at their blatant discussion of how to control power and oppress the people—and more importantly, at how her own speech was being completely ignored.
 
-　　“我的话没说完，我设想的是类似古罗马那样的政体，”于鄂水继续解释道，“贵族共和制或者叫权贵民主制——都一个意思。”
+"I haven't finished. I envision a political system similar to ancient Rome," Yu E'shui continued to explain. "An aristocratic republic or an oligarchic democracy—it's all the same meaning."
 
-　　“元老院？”
+"The Senate?"
 
-　　“对，我们穿越者全体都是元老，元老院掌握一切权力。在元老院内部充分发挥民主。对于广大的归化者，可以给予有限的政治权力，设立一个下院或者类似的机构来代表他们的权力。”
+"Yes, all of us transmigrators will be Senators, and the Senate will hold all power. Within the Senate, we will have full democracy. As for the vast number of naturalized people, we can grant them limited political power and establish a lower house or a similar institution to represent their rights."
 
-　　“所有动物都平等，但是有些动物比其他动物更平等。”
+"All animals are equal, but some animals are more equal than others."
 
-　　“没错，就是这个意思。”于鄂水说，“不过这是后话。早期我们不需要这么复杂的政治体制。简单地说：穿越者全体大会选举产生执委会，由执委会行使行政权力。重大决策和立法，由全体大会投票决定。每个穿越众都有选举和被选举权、还有投票权，不分男女，十八周岁以上一人一票。”
+"Exactly, that's the meaning," Yu E'shui said. "But that's for later. In the early stages, we don't need such a complex political system. Simply put: the General Assembly of all transmigrators elects the Executive Committee, which exercises administrative power. Major decisions and legislation are decided by a vote of the General Assembly. Every transmigrator, regardless of gender, has the right to vote and be elected, one person, one vote, for those over eighteen."
 
-　　“如何决定多数？”
+"How do we determine a majority?"
 
-　　“这个属于细节问题，如果要照顾到全面的民意，可以规定为90％的穿越众参加会议，投票才是有效的。在90％的投票基础上，三分之二为多数。”
+"That's a matter of detail. If we want to take into account the overall public opinion, we can stipulate that a vote is valid only if 90% of the transmigrators attend the meeting. On the basis of that 90% vote, two-thirds constitutes a majority."
 
-　　“这样的大民主会不会有问题？群众有时候是盲目的，很容易会被人煽动，万一刚顺风顺水的发展了几年，打了几次胜仗就有人要去澳洲殖民或者要搞什么屠日灭美的怎么办？投票一通过不就成了决议。”
+"Will such a grand democracy be problematic? The masses are sometimes blind and easily incited. What if, after a few years of smooth development and a few victories, someone wants to colonize Australia or exterminate Japan and America? If the vote passes, it becomes a resolution."
 
-　　“呵呵，的确是这样。”于鄂水笑着说，“如果在穿越者内部实现民主，那么作为民主，众人皆醉我独醒与民主是一对矛盾：如果你发现团体中的大多数人都持着一种‘错误’的观念，那民主的结果就是你该屈服于这种观念。
+"Hehe, that's true," Yu E'shui said with a smile. "If we implement democracy among the transmigrators, then there is a contradiction: if you find that the majority of the group holds a 'wrong' view, the result of democracy is that you should yield to that view.
 
-　　“在一个多数人都想养萝莉的团体里，你坚持养萝莉就是摧残少女必需取缔的结果只能是失败。除非你能说服大家认可你的理念——这也许得很多很多年才能做到，或者极端一些通过某种途径夺权独裁，这样你获得了改造他人思想的权力。”
+"In a group where most people want to raise lolis, if you insist that raising lolis is the destruction of young girls and must be banned, you will only fail. Unless you can persuade everyone to accept your concept—which may take many, many years—or, more extremely, seize power through some means and become a dictator, thus gaining the power to reform others' thoughts."
 
-　　“舆论，关键是舆论。”[萧子山][y001]说。
+"Public opinion, the key is public opinion," said [Xiao Zishan][y001].
 
-　　“没错，舆论可以作为一种导向。控制舆论一定程度上也就是控制了民意。”
+"That's right. Public opinion can be used as a guide. To a certain extent, controlling public opinion is controlling the will of the people."
 
-　　围着操场散步的众人又转了一圈，期间杜雯不断的批判资产阶级民主的虚伪性。
+The group walking around the track completed another lap, during which Du Wen continuously criticized the hypocrisy of bourgeois democracy.
 
-　　“在穿越众内部实行三权分立吗，司法搞独立体制？”有人问。
+"Will we implement a separation of powers among the transmigrators, with an independent judicial system?" someone asked.
 
-　　“没必要，至少一开始没必要，内耗太大了。我们人少不需要这么复杂的均衡。就算要制衡也不在法律领域里。”于鄂水的话虽然没说明，意思是大家都懂的。
+"It's not necessary, at least not at the beginning. The internal friction would be too great. We have too few people to need such a complex system of checks and balances. Even if we need checks and balances, it won't be in the legal field." Although Yu E'shui didn't elaborate, everyone understood what he meant.
 
-　　“呵呵，我觉得我们有点太细了，政治体制说到底还不是一个利益如何分配的问题？”代表穿越者中的北美利益集团的钱水廷发言了，这位40岁生物学硕士已经默默的听了许久，这时才开口说话，“搞思想统一的领导核心是不太现实的。现代人什么思潮都有：左、中、右；黄俄、黄德、皇汉……要让这些人统一思想再干事，估计大家都得给明朝军队杀光——要不也饿死了。这里高学历的又多，个个自视甚高，很多人都有了成型的思想，要想树立唯一的核心根本不可能。所以，穿越者的合作只有寻求利益上的共同点，而不是理念上的一致。我个人认为以股份制形式最适合作为利益分配的基础和方向。股份制就是搞公司。公司是干什么的，为了中华民族的繁荣富强？这也太高尚了吧。穿越者的利益或者需求是什么？和一般人没两样，除了少数舍己为人的理想主义者外，多数人不外乎金钱，名气、女色和权力的。所以即使集团成员的政治理念各不相同，也还是有机会求同存异的进行合作的。”
+"Hehe, I think we're getting a bit too detailed. In the end, isn't the political system just a question of how to distribute benefits?" Qian Shuiting, representing the North American interest group among the transmigrators, finally spoke up. The 40-year-old with a master's in biology had been listening silently for a long time. "Creating a leading core with a unified ideology is not very realistic. Modern people have all kinds of ideologies: left, center, right; pro-Russia, pro-Germany, Han-nationalist... If we have to unify their thoughts before we can do anything, we'll probably all be killed by the Ming army—or starve to death. There are many highly educated people here, each with a high opinion of themselves, and many have already formed their own ideas. It's impossible to establish a single core. Therefore, the cooperation of the transmigrators can only be sought through common interests, not ideological consistency. I personally believe that a joint-stock system is the most suitable basis and direction for the distribution of benefits. A joint-stock system means running a company. What is a company for? For the prosperity of the Chinese nation? That's too noble. What are the interests or needs of the transmigrators? They are no different from ordinary people. Apart from a few selfless idealists, most people are after nothing more than money, fame, women, and power. So even if the group members have different political ideas, there is still a chance to seek common ground while reserving differences and cooperate."
 
-　　“这样鼓吹利益核心导向，穿越者个人利益不能满足的时候必然会叛变革命么！”杜雯质问道，“历史证明，为自身私利而投机革命的人是根本靠不住的——他们随时会抛弃革命事业，只有那些愿意为理想献身的人，才能做成大业。”
+"By advocating for a core orientation of interests like this, won't the transmigrators inevitably betray the revolution when their personal interests are not met?" Du Wen questioned. "History has proven that those who speculate in revolution for their own private gain are fundamentally unreliable—they will abandon the revolutionary cause at any time. Only those willing to sacrifice for their ideals can accomplish great things."
 
-　　“如果我们的目标是为了建立17世纪的第一个社会主义社会，您愿意为这一事业而献身吗？”
+"If our goal is to establish the first socialist society of the 17th century, are you willing to sacrifice your life for this cause?"
 
-　　“我会培养出许多愿意为这事业献身的人的。”她坚定不移地说出了这句话，大家顿时昏倒一片，个别人还口吐白沫。只有[马千瞩][y005]神色如常。
+"I will cultivate many people who are willing to sacrifice their lives for this cause," she said with unwavering conviction. Everyone instantly collapsed, and a few even foamed at the mouth. Only [Ma Qianzhu][y005]'s expression remained unchanged.
 
-　　“我们需要一个基本宪法，五月花当年还有个公约呢。”
+"We need a basic constitution. Even the Mayflower had a compact."
 
-　　“说到这里，我现在有个很奇妙的感觉——像是一次十七世纪的远洋探险。”于鄂水兴奋的搓着手，“一群社会的失意者和幻想者希望能在另一个世界得到新的起点，到新的世界去发财去掠夺去满足欲望。他们有全新的杀戮技术和武器，他们有大堆的紧俏商品。他们冷酷无情地进入新世界。最初只是要求一小块土地容身。后来他们成为帝国的主人！”
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
-[y005]: /characters/y005 "马千瞩"
+"Speaking of which, I have a very strange feeling right now—like this is a 17th-century ocean expedition," Yu E'shui said, rubbing his hands in excitement. "A group of society's losers and dreamers hope to get a new start in another world, to get rich, to plunder, to satisfy their desires. They have brand-new killing techniques and weapons. They have piles of hot commodities. They enter the new world ruthlessly. At first, they only ask for a small piece of land to live on. Later, they become the masters of an empire!"
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
+[y005]: /characters/y005 "Ma千瞩"
