--- a/_posts/2009-10-15-1-04500.md
+++ b/_posts/2009-10-15-1-04500.md
@@ -1,151 +1,117 @@
 ---
 layout: post
-title: 第四十五节 准备出发
+title: "Section 45: Preparing for Departure"
 category: 1
 path: 2009-10-15-1-04500.md
 tag: [normal]
 ---
 
-　　月亮逐渐圆润起来，总部的工作也脱离了按部就班运行的节奏。整个机构地进入到高速运转中去。
+The moon gradually grew full, and the work at the headquarters broke away from its routine rhythm, with the entire organization entering a state of high-speed operation.
 
-　　财务部门将全部可以变现的资产全部换成了RMB，接着又把RMB变成了无数物资。为了防止最后关口出现某些节外生枝的情况，财务组依然保存了大约50万RMB，还把手边还没有变现的十多公斤黄金全部私铸成10克、25克、50克的小条子，准备随时使用——虽然没有现金好用，金子的价值总还是人人都能明白的。
+The finance department converted all liquidatable assets into RMB, and then turned the RMB into countless supplies. To prevent any last-minute complications, the finance team still kept about 500,000 RMB in reserve. They also privately cast the ten-plus kilograms of gold they still had on hand into small bars of 10, 25, and 50 grams, ready for use at any time—although not as convenient as cash, the value of gold was something everyone could understand.
 
-　　除了留守在雷州半岛上货代处的航海人员，所有外派出去的穿越者全部回到了基地，开始最后的准备工作。
+Except for the maritime personnel stationed at the freight forwarding office on the Leizhou Peninsula, all transmigrators who had been dispatched to other locations returned to the base to begin the final preparations.
 
-　　医药卫生组对穿越者的卫生健康情况进行了最后的复查，重点在免疫方面——尽管三令五申的出过多次通知，还是发现有人没有接种却慌称接种完成——甚至有人拿了伪造的接种证明来。
+The medical and health group conducted a final review of the transmigrators' health status, focusing on immunizations. Despite repeated notices, they still found people who had not been vaccinated but falsely claimed they had—some even produced forged vaccination certificates.
 
-　　对某些疫苗来说补种已经来不及了——乙肝疫苗的接种全过程要一年半。卫生组只好增加了疫苗的采购量。
+For some vaccines, it was already too late for a booster shot—the entire Hepatitis B vaccination process takes a year and a half. The health group had no choice but to increase their procurement of vaccines to bring along.
 
-　　“这群人难道不知道这是拿自己的小命在开玩笑么？”河马看着被普查出来的《未完成免疫情况表》，虽然他不知道17世纪的海南的疫病情况如何，但是想都想得出来，那里肯定是各类微生物的乐园，霍乱在20世纪还多次在海南爆发过。
+"Don't these people know they're gambling with their own lives?" He Ma looked at the "Incomplete Immunization Status Table" that the survey had produced. Although he didn't know the epidemic situation in 17th-century Hainan, he could well imagine it was a paradise for all sorts of microorganisms. Cholera had broken out multiple times in Hainan even in the 20th century.
 
-　　“关于角膜切开术校正视力的，也有很多人没做。”兰方方大夫痛苦的说——他不得不在采购的医疗器械里增加了全套的老式验光设备，相比起到处都有的电脑验光仪和电脑磨镜机，这东西还真不好找。
+"Many people also haven't had the corneal incision surgery to correct their vision," Dr. Lan Fangfang said painfully. He had to add a full set of old-fashioned optometry equipment to the medical procurement list. Compared to the ubiquitous computerized refractometers and lens grinders, this old equipment was really hard to find.
 
-　　不好找的东西还有许多。卫生组比较头大的事是他们不能象现代医院那样使用轻轻松松的大量使用一次性的用品，象玻璃的注射器、输液器这些东西现在很难寻觅，与之配套的小型医用消毒锅之类的东西也都销声匿迹了。找了许多医药公司、医疗器械厂和医院的仓库才配齐了东西。许多老式医疗器械上的专用橡胶管早就老化不堪，连配的地方都没有只好专门请企业开模重做——代价高昂。
+Many other things were also hard to find. A major headache for the health group was that they couldn't easily use large quantities of disposable supplies like a modern hospital. Things like glass syringes and infusion sets were now difficult to find, and the small medical sterilizers that went with them had also disappeared. They had to search the warehouses of many pharmaceutical companies, medical device factories, and hospitals to gather everything. The special rubber tubing on many old medical instruments had long since aged and deteriorated, and there was nowhere to get replacements. They had to specially commission a company to create new molds and produce them—at a high cost.
 
-　　执委会对医疗卫生的态度就是用钱无极限——只要能保证尽可能高的医疗水平，用多少都肯批款，结果卫生组成了民生部门里花钱最多的一个组。
+The Executive Committee's attitude towards medical care was one of unlimited spending—as long as it could guarantee the highest possible level of medical care, they would approve any amount of money. As a result, the health group became the biggest spender among all the civil affairs departments.
 
-　　最后就形成了一张几乎可以开医院的清单：
+In the end, it formed a list that could almost open a hospital:
 
-　　1、检查类设备
+1.  **Diagnostic Equipment**
+    *   One gastroscope set, one B-ultrasound set, one X-ray machine set, one colonoscope set, one laparoscope set, one ECG set, 10 monitoring sets, 5 medical microscopes.
 
-　　胃镜一套、B超一套、X片机一套、肠镜一套、腹腔镜一套、心电图一套、监护仪10套、医用显微镜5台。
+2.  **Treatment Equipment**
+    *   2 shadowless lamps (1.5m diameter)
+    *   2 surgical tents
+    *   2 operating tables
+    *   10 oxygen cylinders
+    *   10 ventilators
+    *   2 gastric lavage machines
+    *   2 dental treatment units
+    *   2 defibrillators
+    *   100 glass syringes (1ml, 5ml, 10ml, 20ml, 50ml)
+    *   50 glass IV drip sets
+    *   20 sets of surgical instruments
+    *   10 sets of dental instruments
+    *   5 sets of obstetric instruments
+    *   2 sets of orthopedic instruments and equipment
+    *   Each set: 1 electric knife, 1 sharp and 1 round scalpel, 4 large, medium, and small hemostatic forceps each, 4 curved forceps, 4 hook forceps, 2 large, medium, and small retractors each, 2 large and small toothed forceps each, 2 large and small plain forceps each, 2 large, medium, and small intestinal spatulas.
+    *   Surgical gowns, masks, caps, gloves, etc., in various quantities.
+    *   Large quantities of sutures, dressings, gauze, disinfectant, etc.
 
-　　2、治疗类设备
+3.  **Pharmaceuticals**
+    *   Emergency drugs: Mannitol, Isoproterenol, Epinephrine, Norepinephrine, Verapamil, Cedilanid, Amiodarone, Propafenone, Propranolol, Digitalis, Atropine.
+    *   Large quantities of the anesthetic Lidocaine.
+    *   Large quantities of the diuretic Furosemide.
+    *   Large quantities of antibiotics (Penicillin, Erythromycin, Clindamycin, Cephalosporins, Sulfonamides, Ornidazole, Metronidazole, Ofloxacin, Vancomycin - from low to high efficacy).
+    *   Large quantities of antiviral drugs (Ribavirin).
+    *   Various common drugs, vaccines, and anti-snake venom serums.
 
-　　无影灯2台（直径1.5m）
+4.  **Other Equipment**
+    *   Sterilizers, various stainless steel medical utensils, UV disinfection carts, refrigerators, infant incubators, etc.
 
-　　手术帐篷2顶
+First-aid kits were configured at 5 per person, with one issued directly to each individual as standard equipment.
 
-　　手术台2张
+If not for the fact that they simply couldn't find a seller, the Executive Committee was even prepared to buy a full field hospital set. But after searching many places, they couldn't find one for sale and had to give up. The Executive Committee's obsession with comprehensiveness in medical matters became so extreme that even the doctors in the health group couldn't stand it anymore and had to stop their ever-increasing demands—they even put a CT scanner on the procurement list, and the doctors had to tell them that while it was useful, it wasn't something they couldn't live without...
 
-　　氧气瓶10罐
+As for the personal equipment of the transmigrators, it fully embodied the Executive Committee's spirit of "better to have too much than too little." However, they still configured it in multiple tiers based on different personnel roles.
 
-　　呼吸机10套
+The standard personal configuration for a transmigrator was A-Level, which was mandatory for everyone.
 
-　　洗胃机2台
+At this level, the configuration was mainly to meet the needs of daily production and life, while also providing protection for low-level conflicts and short-distance cross-country travel.
 
-　　牙科治疗机2台
+It included a knock-off version of the US Marine Corps modular backpack, which could be broken down into 6 bags of different sizes. The average transmigrator was not issued camouflage uniforms, only tropical military-green training uniforms and tropical combat boots, one boonie hat and one helmet-style hat, the latter with a special mosquito net head cover. They were also issued goggles, a raincoat, and high-top rubber boots.
 
-　　除颤器2台
+Under normal circumstances, the transmigrators would be housed on the ship or in prefabricated houses at the base, so their lodging items did not emphasize camping. As Hainan is in a subtropical region, they were issued a 15°C rated sleeping bag and a matching moisture-proof mat.
 
-　　玻璃管注射器100只（1ml、5ml、10ml、20ml、50ml）
+As for protective gear and weapons, A-Level transmigrators would not participate in intense conflicts and only needed limited protection. Therefore, they were issued an anti-stab vest, gloves, and one Type 80 steel helmet—the reason for not choosing a lighter, newer helmet was that organic materials age easily, while the old Type 80 helmets were abundant and cheap.
 
-　　玻璃吊瓶50套
+Communication items were a walkie-talkie and a survival whistle. The walkie-talkie had a communication range of over 1 km and could be networked.
 
-　　手术器械20套
+Personal items issued:
 
-　　牙科器械10套
+*   Waterproof outdoor watch (with functions for altitude, temperature, air pressure, electronic compass, timer, and alarm).
+*   One knock-off Swiss Army knife and one short machete.
+*   Compass.
+*   Headlamp.
+*   Flashlight (friction-powered to save batteries).
+*   Windproof lighter.
+*   Small steel cup (can be used for drinking anything, and as a washing cup in the morning).
+*   Outdoor water bottle (effective at preventing corrosion, cool color).
+*   Military canteen (comes with a mess tin, which is quite practical).
+*   One set each of mess tin, enamel food tray, and travel cutlery.
 
-　　接生器械5套
+Finally, each person also received two days' worth of emergency rations: energy bars and beef jerky, plus one sewing kit and one first-aid kit.
 
-　　骨科器械和设备2套
+As for toiletries and general underwear, socks, and clothes, individuals were to provide their own.
 
-　　每套：电刀一把、手术刀尖头圆头各一把、止血钳大中小各4把、弯钳4把、勾钳4把、拉钩大中小各2把、有齿镊大小各2把、平镊大小各2把、压肠板大中小各2。
+Above A-Level, there were B-Level (for general military personnel and long-range travelers) and C-Level (for scouts and long-range field surveyors). In these two levels, camouflage uniforms and GORE-TEX jackets replaced the training uniforms, and many more professional outdoor, military, and specialized items were added. The list was long and varied. However, many of the items in these two tiers were not issued regularly but were given out temporarily when needed and had to be returned afterward.
 
-　　手术服、口罩、帽子、手套等等若干。
+According to the committee's repeated calculations, each transmigrator could carry 200kg of personal belongings, including the issued equipment. As long as the total weight was not exceeded, there was no limit on the types of personal items, but firearms were not allowed to be carried privately (any brought must be handed over for unified storage).
 
-　　大量缝合线、敷贴、纱布、消毒液等等
+[Ma Qianzhu][y005] tirelessly led a team to inspect the packing of each transmigrator's belongings and couldn't help but shake his head. Almost all of them brought various kinds of computers, but very few thought to bring a notebook and a pen. Many also brought entertainment devices like MP3 players and PSPs, as if they were going to a place with power outlets everywhere. Yet they brought very few items crucial for personal hygiene, like underwear, socks, and toiletries.
 
-　　3、药品
+There was no end to such equipment, which seemed more suited for a hiking trip than a transmigration. The committee decided to adjust everyone's equipment, persuading them not to bring so many useless things. The filtered-out items could be mailed home, but most people firmly refused to leave their computers behind—even if the transmigration was successful and they all became high-ranking cadres, it would be impossible to produce a computer within their lifetimes.
 
-　　抢救类：甘露醇、异丙肾上腺素、肾上腺素、去甲肾上腺素、异搏定、西地兰、胺碘酮心律平、心得安、洋地黄、阿托品
+"Forget it, let them bring them. It will give us more spare computer parts," sighed Shi Kai, who was in charge of all the transmigrators' IT work. His own burden was not light; he had a full cabinet of IT equipment, and he wasn't sure if his undergraduate level of knowledge was enough to handle it.
 
-　　麻醉药利多卡因大量
+[Wang Luobin][y003] and others in charge of material procurement had to travel back and forth to nearby cities again—to purchase all sorts of things they hadn't thought of at first but realized were useful as the departure neared.
 
-　　利尿剂呋塞米大量
+The packing process was spent in constant re-checking and supplementing. The hustle and bustle didn't stop until late at night. The next morning, the transmigrators gathered on the training ground, each wearing the uniformly issued clothing.
 
-　　大量抗生素（青霉素，红霉素，克林霉素，头孢类，磺胺类，奥硝唑，甲硝唑，奥能，万古霉素 药效由低到高）
+"Not bad, they look like an army," Xi Yazhou said, surveying the transmigrators sitting on the ground waiting to board.
 
-　　大量抗病毒药（病毒唑）
+"Hmph, a disorderly mob," [Ma Qianzhu][y005] grumbled. The scene before him was less like an army and more like a reenactment of his university military training.
 
-　　各种常用药物、疫苗、抗蛇毒血清。
-
-　　4、设备
-
-　　消毒锅、各种不锈钢医疗器皿、紫外线消毒车、电冰箱、婴儿保温箱等等。
-
-　　急救包，按每人5个配置，其中1个直接发到个人手中作为标准装备。
-
-　　要不是实在没地方买，执委会还准备买野战医院一套，但是跑了很多地方都没这东西出售，只好作罢。执委会对医疗问题好大求全的偏执使得卫生组的医生都看不下去了，不得不阻止他们越来越多的要求——连CT机都上了采购清单，他们不得不说，这东西虽然也很有用，但是并不是少了就不行……
-
-　　至于穿越众的个人装备，更是体现了执委会宁滥勿缺的精神。不过他们还是按照不同的人员分工进行了多级配置。
-
-　　穿越者的个人配置为A级，即普通级，属于每人必备。
-
-　　在这个级别里，穿越众的配置主要是为了满足日常的生产生活需要，兼顾低级别的冲突的防护和短途越野。
-
-　　山寨版美海军陆战队的组合背包，可分解成6个大小不同的包。一般穿越者不配发迷彩服，只配发了热带军用绿色作训服和热带作战靴，奔尼帽和盔形帽各1顶，后者配有专门的防蚊头罩，另外配风镜、雨衣和橡胶高筒水靴。
-
-　　一般情况下穿越者都住宿在船上或者基地内的简易房内。所以住宿物品不强调野营化。海南本身地处亚热带地区，配发15度的温区睡袋和配套的防潮垫。
-
-　　至于防护装备和武器，A级配置的穿越众不参加激烈的冲突，只需要作有限的防护即可。所以配发的是防刺背心、手套和80式钢盔1顶——不选用更轻便的新头盔是有机材料容易老化，老式的80盔存量很大价格便宜。
-
-　　联络物品是对讲机和救生哨。对讲机是通话距离能在1Km以上，能组网。
-
-　　个人物品配发：
-
-　　防水户外手表（可测海拔、气温、气压、带电子罗盘、记时和闹钟等功能）
-
-　　山寨版瑞士军刀和短砍刀各一把
-
-　　指南针
-
-　　头灯
-
-　　手电（磨擦生电的，可节约电池）
-
-　　防风打火机
-
-　　小钢杯（喝什么都可以，早上还可作为洗漱杯）
-
-　　户外水壶（可以有效的防腐，颜色比较酷）
-
-　　军用水壶（带一个饭盒，这点比较实用）
-
-　　饭盒、搪瓷饭盘、旅行餐具各一套。
-
-　　最后，每人还有二天分的应急干粮：能量棒和牛肉干。另有针线包和急救包各一个。
-
-　　至于盥洗用品和一般的内衣、袜子和衣服，则由个人自备。
-
-　　在A级之上还有B级——一般军人、远程旅行人员和C级——侦察兵、远程野外勘探人员两个级别。在这两个级别里，除了迷彩服、冲锋衣替代了作训服，还增加了更多专业户外用品和军用、专业装备。琳琅满目，不一而足。不过这二级的许多用品，在平时是不配发的，只在需要的时候临时发给，事后要交还。
-
-　　根据委员会的反复核算，每名穿越者可携带200kg的私人物品，含配发装备在内。个人物品只要不超过总重携带种类不限，但是不能私自携带枪支（携带的必须上交统一保管）。
-
-　　[马千瞩][y005]不辞辛苦的带人检查了每个穿越者的携带物品打包情况，不由得大摇其头。几乎所有穿越众都带了各式各样的电脑，却很少人想到该带一本笔记本一支笔，不少人还带了MP3、PSP之类的娱乐设备。好像他们要去的地方到处都有电源插座。对个人卫生至关重要的内衣、袜子、盥洗卫生用品之类却带的很少。
-
-　　类似的不像去穿越，倒象去远足的装备不一而足。委员会决定对全部人员的装备做调整。说服他们不要带那么多无用的东西去。筛选下来的东西可以邮寄回家，但是多数人都坚决不同意把自己的电脑留下——就算穿越成功，大伙都成了离休干部级别，电脑在自己的有生之年还是不可能生产出来的。
-
-　　“算了，还是让他们带吧，也好多一些电脑配件的后备。”负责全部穿越众资讯工作的石开叹了口气——他自己的担子也不轻，满满一个柜的IT资讯设备，以他大学本科的水平不知道是不是搞得定。
-
-　　负责物资采购的[王洛宾][y003]等人不得不再次往返于附近的城市－采购各种各样开始想不到，到临出发才意识到有用的东西。
-
-　　打包工作在不断的反复检查和补充中度过。喧嚣声到很晚才停止，第二天一早穿越众们都聚集在训练场上，每个人都换上了统一发放的服装。
-
-　　“不错，象支军队了。”席亚洲审视了下席地而坐正在等待上船的穿越众们。
-
-　　“嗯，乌合之众。”[马千瞩][y005]闷闷不乐地说了一句。眼前的景象与其说象军队，倒不如说大学生时代军训的再现。
-
-　　“不要这么说，老马，”席亚洲豪情满怀地拍了下他的肩膀，“我们还要一起席卷全中国……”
+"Don't say that, Old Ma," Xi Yazhou said, clapping him on the shoulder with heroic spirit. "We are going to sweep across all of China together..."
 [y003]: /characters/y003 "王洛宾"
 [y005]: /characters/y005 "马千瞩"
