--- a/_posts/2009-10-22-2-00500.md
+++ b/_posts/2009-10-22-2-00500.md
@@ -1,87 +1,80 @@
 ---
 layout: post
-title: 第五节 港口建设（二）
+title: "Section 5: Port Construction (Part 2)"
 category: 2
 path: 2009-10-22-2-00500.md
 tag: [normal]
 ---
 
-　　“U.C0079、U.C0083、U.C0093、A.C0197人员全部到绿滩集合，准备卸载车辆。”
+"U.C. 0079, U.C. 0083, U.C. 0093, and A.C. 0197 personnel, all assemble at Green Beach, prepare to unload vehicles."
 
-　　随着步话机的呼叫，刚刚从栈桥上下来几个专业组懒洋洋的从沙滩上爬了起来——代号为红滩，红滩是从1号码头登岸的登陆点，黄滩则是小艇登陆点，绿滩是驳船、登陆艇登陆点——坐了一天的船，一脚踏实地腿脚都有点发飘了。在休息点卸了大背包，都坐在石头上喘气，说是人员休息点，其实除了一张放着电脑和账本的折叠小桌子和一块大书人员休息点几个大字的木牌之外别无他物。满是大大小小圆砾石的沙滩上错落有致竖着好几块牌子：厕所、食水点等等，表示将来会有这些东西。
+With the call from the walkie-talkie, several professional groups that had just come down from the jetty lazily got up from the sandy beach. The landing points were color-coded: Red Beach was the landing point from Pier 1, Yellow Beach was for small boats, and Green Beach was for the barge and landing craft. After sitting on a boat for a whole day, their legs felt a bit wobbly on solid ground. They had dropped their large backpacks at the rest stop and were all sitting on rocks, catching their breath. It was called a personnel rest stop, but in reality, there was nothing there except a small folding table with a computer and a ledger, and a large wooden sign with the words "Personnel Rest Stop." The beach, covered with large and small round pebbles, had several signs scattered about: "Toilets," "Water Point," etc., indicating that these things would be there in the future.
 
-　　这四个组，U.C的是有驾驶大型车辆执照的，AC有工程机械执照的。北美分舵的钱水协虽然一再表示自己的意向是到军事组拿枪保卫穿越政权，但是他填写的专业技能——开大货柜车使得他最后落到了UC.0079去了。和一群根本不认得的人一起工作有点无趣，不过他马上发现了比自己更郁闷的人：白羽，装甲兵指挥专业、兵器设计与工程设计相关专业毕业的军事人才，被打发来开履带拖拉机。
+Of these four groups, the U.C. ones were for those with licenses to drive large vehicles, and the A.C. one was for those with construction machinery licenses. Although Qian Shuixie from the North American branch had repeatedly expressed his desire to join the military group and take up a gun to defend the transmigrator regime, the professional skill he had listed—driving large container trucks—had landed him in U.C. 0079. Working with a group of people he didn't know at all was a bit boring, but he soon found someone even more depressed than himself: Bai Yu, a military talent who had graduated with a major in armored command and had related expertise in weapons design and engineering, was now assigned to drive a tracked tractor.
 
-　　为了在上岸后能够尽快展开基建工程，蒙德和执委会在组织在装船前就将物资做了一些分类，将登陆后马上会用到的资材都集中装载在1500吨的自推驳船上，包括各种车辆、建筑工程机械和基建物资。
+To be able to start infrastructure projects as soon as possible after landing, Meng De and the Executive Committee had organized the classification of materials before loading the ship. All materials that would be needed immediately after landing were concentrated on the 1,500-ton self-propelled barge, including various vehicles, construction machinery, and infrastructure materials.
 
-　　平甲板自推驳船的满载吃水不过1.83米，虽然比不得登陆艇能够直接冲滩上岸，怎么也比大型货船离岸要近。当然这样的水深车辆也是没法直接下水的，所以这里也装配了一个浮动码头，称为2号浮码头。
+The full-load draft of the flat-deck self-propelled barge was only 1.83 meters. Although it couldn't directly run aground on the beach like a landing craft, it could get much closer to the shore than a large cargo ship. Of course, at this depth, vehicles still couldn't be driven directly into the water, so a floating pier, called Floating Pier No. 2, was also assembled here.
 
-　　自推驳是没有车辆跳板的，它自身又不具备吊杆。好在工程组对此事早有准备，2号浮码头上安装了一组车辆上下跳板，
+The self-propelled barge had no vehicle ramp and no derrick of its own. Fortunately, the engineering group had prepared for this. A set of vehicle ramps was installed on Floating Pier No. 2.
 
-　　“准备卸车了！大家注意安全，穿好救生衣，万一有落水的可能性马上从车里出来，不要怕，大伙不都开车上过摆渡轮吗，一样的……”白羽身为这四个组的临时头头，一边进行安全教育一边打气。
+"Prepare to unload the vehicles! Everyone, pay attention to safety, wear your life jackets. If there's any possibility of falling into the water, get out of the vehicle immediately. Don't be afraid, haven't we all driven onto a ferry before? It's the same..." Bai Yu, as the temporary head of these four groups, gave a safety briefing while trying to boost morale.
 
-　　这几十个人你看我我看你，心想这能一样吗？从这晃悠悠的甲板上把车启动起来，开上狭窄的跳板，再下到那一样晃来晃去的浮码头上——这玩意难度也太高了吧？
+The dozens of people looked at each other, thinking, *How can this be the same?* Starting a vehicle on this swaying deck, driving it onto a narrow ramp, and then down to that equally swaying floating pier—wasn't this a bit too difficult?
 
-　　白羽见大家都在迟疑，知道得有人先做出表率来才行。好歹自己当年在部队里也开过坦克，把心一横，叫了声：“帮我看着点！”第一个爬上那台东方红1202通用型履带式拖拉机。
+Seeing everyone hesitating, Bai Yu knew that someone had to set an example. He had driven tanks in the army before, so he steeled himself, shouted, "Spot for me!" and was the first to climb onto the Dongfanghong 1202 general-purpose tracked tractor.
 
-　　拖拉机启动起来的轰鸣声让白羽稍稍心安，驾驶室的视角很好，24V电瓶启动起来又快又稳。白羽在部队开过坦克、装甲输送车，也开过各式各样的军用工程车辆，上下舟桥或者舟桥驳都是小菜一碟，不过眼下的这浮码头、车辆跳板纯属手工山寨货，强度、承载力到底是多少只有天知道。
+The roar of the tractor starting up calmed Bai Yu's nerves slightly. The view from the driver's cab was good, and the 24V battery started it up quickly and smoothly. Bai Yu had driven tanks, armored personnel carriers, and various military engineering vehicles in the army. Driving onto pontoon bridges or barges was a piece of cake for him. However, the current floating pier and vehicle ramp were purely handmade, knock-off products. Only heaven knew their true strength and load-bearing capacity.
 
-　　有点迟疑地看着在蓝色的水面上摇摇晃晃的跳板还有跳板下面那高低起伏的码头，他启动了发动机，船明显的飘动了一下。他顾不得许多，眼睛紧盯着挥着小旗指挥的钱水协，履带在钢板上打着转，发出龇牙咧嘴般的磨擦声，一步一步的蹭上了跳板。履带刚压上跳板，下面的浮码头就飘动起来，跳板都移位了，吓得周围的人都呆了，这时候在码头指挥工作的工程组卓天敏见此情景猛跑了过来：
+He looked hesitantly at the swaying ramp on the blue water and the undulating pier below it. He started the engine, and the ship clearly drifted a bit. He didn't have time to worry. His eyes were fixed on Qian Shuixie, who was directing with small flags. The tracks spun on the steel plate, making a grating sound as it inched onto the ramp. As soon as the tracks were on the ramp, the floating pier below began to drift, and the ramp shifted. The surrounding people were stunned. At this moment, Zhuo Tianmin from the engineering group, who was directing work on the pier, saw the situation and ran over.
 
-　　“都发什么愣！快拉住钢丝绳！”
+"What are you all staring at! Quick, pull the steel cables!"
 
-　　工程组在驳船上早就装了4根钢丝绳，为得就是在卸载的时候可以用人工拉紧，尽可能的减少船只和码头的漂移。
+The engineering group had already installed four steel cables on the barge, so that they could be pulled manually during unloading to minimize the drift of the ship and the pier as much as possible.
 
-　　“快拉快拉！”在他的不断的吼叫声中，四周的人赶紧都去抓钢丝绳，身体朝后的猛拽，毫不容易才让拖拉机开上了浮码头。
+"Pull, pull!" With his constant shouting, the people around them quickly grabbed the steel cables and pulled back with all their might. With great difficulty, they managed to get the tractor onto the floating pier.
 
-　　有了第一次成功的经验，接下来的事情就容易多了，二个小时过后，穿越众拥有的工程机械都上了岸，整齐的停放在沙滩上：
+With the first successful experience, the rest of the work became much easier. Two hours later, all the construction machinery owned by the transmigrators was on shore, parked neatly on the beach:
 
-　　二台东方红1202通用型履带式拖拉机，带挖泥斗、推土铲
+*   Two Dongfanghong 1202 general-purpose tracked tractors, with excavator buckets and bulldozer blades.
+*   Four Dongfanghong 404Z1W backhoe loaders (medium-wheeled tractors).
+*   Four Dongfanghong 170V wheeled tractors (small-wheeled tractors).
+*   Ten Changchai single-cylinder diesel dump trucks.
+*   One 18-ton Dongfanghong wheeled road roller.
+*   One 25-ton mobile crane.
+*   Two towable concrete mixers.
+*   Four air compressors.
 
-　　四台东方红404Z1W前装（货）后挖（土）型拖拉机（中轮拖）
+To reduce the complexity of maintenance, most of the construction machinery was from the Dongfanghong series produced by the Luoyang First Tractor Factory.
 
-　　四台东方红170V轮式拖拉机（小轮拖）
+With so much equipment, it would be no problem to build a new city, let alone a small temporary base.
 
-　　十台常柴动力单缸柴油翻斗车
+But Mei Wan and Bing Feng, who were in charge of infrastructure work, still felt a bit helpless. They had machinery, fuel, and electricity... but the problem was the lack of raw building materials.
 
-　　一台18吨东方红轮式压路机。
+The barge was loaded with a lot of steel bars and cement, but the engineering group had neither yellow sand nor crushed stone, so they couldn't use concrete, the most common and convenient modern building material. Traditional bricks and tiles were, of course, an option, but where could they find bricks on this desolate beach? Needless to say, the Ming Dynasty's Lingao County definitely had brick kilns, but their specific location still needed to be scouted.
 
-　　一台25吨汽吊
+Of course, some basic construction didn't require any raw materials and could be done with what was available. Bing Feng's task was to build a cargo yard at Red Beach. This was just a temporary cargo yard, so there was no need for ground hardening. Simply raising and compacting the ground, supplemented by a certain drainage system, would be sufficient. Based on Bing Feng's past experience in construction companies, a project of this scale could be completed in a single morning by a team of ten to twenty migrant workers using manual tools like shovels, pickaxes, and wheelbarrows. Now that they had a full set of mechanized equipment, they had to perform even better.
 
-　　二台牵引式混凝土搅拌机
+The transport group thus became the cargo yard construction team. The entire Red Beach was filled with the roar of machinery. Vehicles bumped and ran back and forth, kicking up dust half a sky high. Everyone knew that the Red Beach cargo yard was under construction. The fiery atmosphere attracted the ubiquitous Ding Ding and his partner. The foreign girl was full of vigor. The temperature on the beach was only twenty-seven or twenty-eight degrees, but she was wearing a tight-fitting small vest and denim hot pants, climbing up and down to take pictures. Her two bare, snow-white legs flashed before everyone's eyes. From time to time, she would stick out her round buttocks to get a shot, causing the blood of all the men, young and old, on the construction site to surge, with obvious physiological changes. After a series of incidents where a dump truck almost hit someone and an excavator dug in the wrong direction, Bing Feng had to reluctantly send the two of them away.
 
-　　四台空压机
+The ground of the yard had a certain slope from south to north. After measurement, they found that the slope was less than 1:10. Generally, under such slope conditions, topsoil removal was not necessary. Simply removing the large stones and miscellaneous trees on the surface would be enough before direct compaction. However, after taking a soil sample, they found that the surface layer was almost entirely loose sand and small pebbles, with poor adhesion. In the end, they still used a bulldozer to completely remove the surface sandy soil and pebbles.
 
-　　为了减少维护的复杂性，多数工程机械都选择了洛阳第一拖拉机厂的东方红系列。
+Since the cargo yard was on a slope, the entire foundation was of a semi-cut, semi-fill type. First, they used an excavator to dig an intercepting ditch at the highest point of the slope on the south side to collect the rainwater flowing down the slope. Then, they dug drainage ditches on the east and west sides to discharge the water directly into the bay. The excavated soil was used as fill for the foundation.
 
-　　这么多的设备别说一个小小的临时基地，就是建一所新城市也不在话下。
+After removing the surface gravel, the soil below was sandy soil. This type of soil has good water permeability and is stable after compaction. Bing Feng used all of this soil as the foundation soil. The fill, transported by small dump trucks, was poured onto the foundation. For every 20cm of fill, a road roller would go back and forth three times to compact it. Then more fill, then more compaction. After two consecutive rounds, it was basically completed. Bing Feng had originally planned to lay a layer of crushed stone on top of the entire yard, but they didn't have a stone crusher, and the stones on the beach were of various sizes and irregular shapes, making them difficult to use. So, he skipped this step. The completed cargo yard was slightly higher than the ground, rectangular in shape when viewed from above, with slopes on three sides. Below the slopes were drainage ditches. On the side facing the bay, a simple road was built to the standard of a temporary road to connect to the pier.
 
-　　但是负责基建工作的梅晚和冰风还是有些一筹莫展的感觉。机械设备、燃料、电力都有了……问题是没有建筑材料原料。
+"If we had enough steel beams, we could build a shed for this cargo yard," Bing Feng said with some regret. "For now, we can only cover it with tarps."
 
-　　驳船上装载了许多钢筋和水泥，但是工程组手里即没有黄沙也没有碎石，没法使用现代建筑最常见也最方便的混凝土，传统的砖瓦当然也是一个选择，但这荒芜的海滩上哪来的砖呢？不用说大明的临高县肯定是有砖窑的，具体在哪里则还需要人去侦察。
+"We don't have asbestos tiles for the roof either," Mei Wan said.
 
-　　当然有些基础建设并不需要什么原料，因陋就简就成。冰风的任务是在红滩修货物堆场。这只是一个临时性的货物堆场，没有必要进行地面硬化处理。简单的地面堆高压实，辅以一定的排水系统就可以了。以冰风过去在建筑公司的经验，这样规模的工程一二十人的民工队，靠铁锹、十字镐、手推车这类手工工具一个上午就能搞定，现在他们全套机械化施工，得表现的更好一些才行。
+"That's not a problem. We can just cover it with wooden planks. Temporary buildings don't need to be so particular. I'm mainly worried about the cement from the barges. If it gets rained on, it can only be used as earthwork for foundations. If we run out of cement, many things will be difficult to do."
 
-　　运输组就这样变成了货场建筑队，整个红滩上机器轰鸣，车辆来回颠簸奔走，扬起来的灰尘有半天高，每个人都知道红滩货场已经在动工了。火热的气氛把无处不在的丁丁两口子给吸引过来了。洋妞就是生猛，海滩上的气温不过二十七八度，就穿着个紧身小马甲牛仔热裤爬上爬下的拍照，两条光光的雪白大腿在大伙面前晃来晃去，不时还掘着滚圆的屁股抢镜头，看得工地上的老老少少个个气血翻涌，生理变化明显。在接连发生几次翻斗车差点撞人和挖土机挖偏方向之后，冰风只好忍疼割爱的把这二位赶走了。
+"Wooden planks? Speaking of which, where is the wood? The camp's watchtowers, and the toilets, all need wood."
 
-　　堆场的地面自南向北有一定的坡度，经过测量，发现坡度小于1：10，一般这样的坡度状况可以不进行表土清除，简单的去掉表层的大块石头、杂树之类即可直接进行堆夯，但是取了土样之后发现表层几乎全是松散的沙子和小砾石，附着力不强，最后还是用推土机将表层沙性土和大小砾石完全清除。
+"We are organizing manpower to unload the cargo tarps from the ships, striving to get them down as quickly as possible to cover the perishable goods," said Dai Xie, the administrator assigned to Red Beach by the Planning Commission. "As for the wood, we don't have any statistical data yet..."
 
-　　堆货场处于斜坡上，所以整个堆场地基采取的是半填半挖式。首先在堆场的南面坡度最高处用挖掘机开挖截水沟，收纳从斜坡上斜下来的雨水，再分别从东西两面开挖排水沟直接排放到海湾内，开挖出来泥土则作为地基填土。
+Wood is the earliest and most widely used natural material by mankind. The transmigrators certainly would not give up this easily obtainable and easy-to-process material. From the very beginning, the human resources group had allocated a considerable amount of labor to logging.
 
-　　去掉表层沙砾之后，下面的土样是砂性土，这种土透水性好，压实后稳定。冰风就全部取了这样的土作为地基土。用小翻斗车运来的填土倒在地基上，每填埋20CM高就用压路机来回碾压3次，再填土，再碾压。连续二次之后就算基本完工了。冰风原来还打算在整个场地上面铺一层碎石，不过他们没有碎石机，沙滩上的石头大大小小，形状也不规则，不太好利用。就省却了这一步。完成后的整个堆货场略高出地面，俯视呈长方形，三面有斜坡，坡下是排水沟，朝向海湾的一面按临时公路的标准修筑了一条简易路连接码头。
+In the minds of many, since Hainan is a tropical and subtropical island, it must be a place of swaying coconut trees and dense forests. Some even thought that Hainan was covered in tropical rainforests. In fact, due to different terrains, climate differences, and long-term man-made development and destruction, the vegetation condition of Hainan is quite complex. By the 1950s, Hainan's forest coverage was only 12.8%, mostly concentrated in the Diaoluo, Jianfeng, and Bawang mountains in the central part of the island. Although Hainan's forest coverage had reached 51.8% by the 21st century, it was mainly composed of artificial forests and secondary forests.
 
-　　“有足够钢梁的话，就可以给这个货场搭建一个棚子了。”冰风有些遗憾，“现在只能兜盖雨布了。”
-
-　　“那也没有石绵瓦盖屋顶。”梅晚说。
-
-　　“这倒不要紧，用木板覆盖就是了，临时性建筑不用那么讲究。我主要是怕那些驳船上下来的水泥，下雨被淋了的话就能当土方填地基了。要是没了水泥，很多事情就难办了。”
-
-　　“木板？说起来木材在哪里呢？营地的塔楼、还有厕所，都得要木材。”
-
-　　“我们正在组织人力卸货船上的盖货雨布，力争最快速度送下来把易损货都覆好。”戴谐是计委派驻红滩的管理员，“木材，到现在还没有统计数据出来……”
-
-　　木材，是人类使用最早，也是最为广泛的一种自然材料。穿越者们当然不会放弃这种获取容易，加工难度低的材料。从一开始，人力组就分配了相当多的劳动力去伐木。
-
-　　在许多人的印象里，海南既然是热带、亚热带地区的海岛，一定是一个椰树婆娑，森林茂密的地方，更有人以为海南的到处都是热带雨林，其实由于地形不同、气候差异和长期人为开发的破坏，海南的植被状况是相当复杂的。到二十世纪的五十年代，海南的森林覆盖率只不过是12.8％而已。基本都集中在岛屿中部的吊罗山、尖峰岭和霸王岭。21世纪的海南森林覆盖率虽然已经达到了51.8％，但是基本都是以人工林、次生林为主。
-
-　　临高是典型的热带季风气候，干湿两季明显，天然植被以热带稀树草原为主，从来也没有广袤的森林。而且这里因为开发历史悠久，稍大一些的天然树林早就被砍伐一空了，次生林的质量也不高。当穿越众准备向17世纪临高索取木材的时候，他们面临的就是这样一个匮乏的环境。
+Lingao has a typical tropical monsoon climate, with distinct dry and wet seasons. The natural vegetation is mainly tropical savanna, and there have never been vast forests. Moreover, due to its long history of development, any slightly larger natural forests had long been cut down, and the quality of the secondary forests was not high. When the transmigrators prepared to demand wood from 17th-century Lingao, this was the scarce environment they faced.
