--- a/_posts/2009-10-23-2-00600.md
+++ b/_posts/2009-10-23-2-00600.md
@@ -1,90 +1,90 @@
 ---
 layout: post
-title: 第六节 港口建设（三）
+title: "Section 6: Port Construction (Part 3)"
 category: 2
 path: 2009-10-23-2-00600.md
 tag: [normal]
 ---
 
-　　终于到了。
+Finally, they had arrived.
 
-　　董时叶望着不到300米外的贫瘠沙滩，绿色的树丛，秋天早晨的阳光和煦，晒着很舒服。该死的上帝，我终于来到古代了——我干嘛要来古代？
+Dong Shiye gazed at the barren sandy beach less than 300 meters away, the green groves of trees. The autumn morning sun was warm and comfortable. *Damn it, God, I've finally come to ancient times—why did I want to come to ancient times?*
 
-　　这个的问题在脑海中一闪而过，接着就被后面的人猛捅腰推搡着前进了。甲板上闹哄哄的，人头济济，虽说是有个码头，但总不是十六铺客运码头，没有舒舒服服的带遮阳蓬和扶手的舷梯，除了直上直下的金属舷梯，就是大幅的绳网——身为曾经的校军事爱好者协会的会长，小董很自然地想起来了诺曼地登陆的照片，美国大兵也是爬着这东西下到登陆艇上去解放欧洲，顺便爱护一下各国妇女们的。看图片当时也没觉得怎么样，此时站着起伏的甲板上，探头往外看去，这足有好几层楼的舷墙下面，蓝幽幽的海面上，浮码头和小艇一起一浮的，看了两眼就头晕目眩起来，腿肚子都有点抖了。
+This question flashed through his mind and was then pushed aside by the person behind him, who jabbed him in the waist. The deck was noisy and crowded. Although there was a pier, it was not the Shiliupu passenger terminal with comfortable, covered gangways with handrails. Besides the straight-up-and-down metal gangways, there were also large rope nets. As the former president of his school's military enthusiast association, Dong Shiye was naturally reminded of photos of the Normandy landings. American GIs had also climbed down these things to the landing craft to liberate Europe, and to care for the women of various countries along the way. Looking at the pictures back then, he hadn't thought much of it. But now, standing on the undulating deck and looking out, below the ship's rail, which was several stories high, on the dark blue sea, the floating pier and the small boats bobbed up and down. Just looking at them for a moment made him dizzy, and his legs began to tremble.
 
-　　浮码头的面积不够，很多人还得靠船上的几条划艇转运上岸。人们纷纷攀着网绳下到艇上，不时有人用长绳把各种奇形怪状的包裹从甲板上吊下来，“别慌、别慌，当心小船”“别上来啦，船要沉啦……”的声音不绝于耳，看来大家的心情都是一样滴，快点上岸，开辟属于自己的时代。
+The floating pier was not large enough, so many people had to be transferred to shore by the few rowboats on the ship. People climbed down the rope nets to the boats. From time to time, people used long ropes to lower various oddly shaped packages from the deck. Cries of "Don't panic, don't panic, watch the boat!" and "Don't come up, the boat is going to sink!" were endless. It seemed everyone was in the same mood: get ashore quickly and start their own era.
 
-　　这时，出现了第一个意外，一个胖子在递行李时脚下打滑，脑袋先磕在船舷上，然后栽下了海，甲板上、海面上立刻沸腾了：“席亚洲落水啦……”“快捞人啊……”
+At this moment, the first accident occurred. A fat man slipped while passing luggage, his head hit the ship's rail first, and then he fell into the sea. The deck and the sea immediately erupted: "Xi Yazhou has fallen into the water..." "Quick, save him..."
 
-　　混乱的状态下，高音喇叭又在不断的吼叫，“C0071、C0077、C0081……伐木任务！”
+In the midst of the chaos, the high-powered loudspeaker was constantly roaring, "C0071, C0077, C0081... logging mission!"
 
-　　C0081？这不是自己这组吗？董时叶看了看自己的臂章。
+C0081? Wasn't that his own group? Dong Shiye looked at his armband.
 
-　　“就是俺们组了。”说话的是一个肤色黝黑，筋骨强健的男人，背包上捆着工兵铲，懒洋洋的靠着舷墙，“我叫柳正……”
+"That's our group," said a dark-skinned, sturdy man with a sapper shovel tied to his backpack, leaning lazily against the ship's rail. "My name is Liu Zheng..."
 
-　　双方通报了姓名，既然分在同一组，就是一个战壕里的战友了。
+They exchanged names. Since they were in the same group, they were now comrades in the same trench.
 
-　　“伐木？”这活新鲜，董时叶虽然也是野外旅行爱好者，看过植物图鉴，砍过柴，斧子可从来没拿过。
+"Logging?" That was a new one. Although Dong Shiye was also an outdoor travel enthusiast, had looked at plant identification guides, and had chopped firewood, he had never held a felling axe before.
 
-　　“没干过。”柳正苦笑了一下，“红烧法克犹！我明明报得特长是野外探险！伐木也算野外探险？”
+"Never done it," Liu Zheng said with a bitter smile. "FML! I clearly reported my specialty as wilderness exploration! Is logging considered wilderness exploration?"
 
-　　“也没工具么！”
+"And we don't have any tools!"
 
-　　“工具倒不怕，肯定预备着。问题伐木可是技术活啊，而且很危险！这里有专业伐木的没有？”
+"Don't worry about the tools, they must have prepared them. The problem is, logging is a skilled job, and it's very dangerous! Are there any professional loggers here?"
 
-　　临近的被叫到几个组的人都阴沉着脸，答案显然是否定的。
+The people in the nearby groups who had been called all had grim faces. The answer was obviously no.
 
-　　这边刚把军事组首长席亚洲捞起来，送进了船上的医务室，那边又出了人为的堵塞问题。
+Over here, they had just fished out the military group's leader, Xi Yazhou, and sent him to the ship's infirmary. Over there, a man-made blockage had occurred.
 
-　　自从一早上，蒙德连蒙带RP大爆发的把船开进了港湾，实实在在的停泊在登陆侦察队标定的深水泊位抛下双锚之后，他这个执委会心目里的二把刀就升级为一把刀了。俨然成了登陆总指挥[马千瞩][y005]的总顾问。
+Since morning, after Meng De, with a combination of bluffing and a massive stroke of luck, had sailed the ship into the harbor and securely dropped double anchors at the deep-water berth marked by the landing reconnaissance team, his status in the eyes of the Executive Committee had been upgraded from a half-baked expert to a full-fledged one. He had become the chief consultant to the landing commander, [Ma Qianzhu][y005].
 
-　　整个船队的卸货工作，完全由他在指挥了。这不仅装货工作是由他安排的，也因为杂货船的装卸货物本身就是一项技术性很强的工作，一艘万吨杂货轮，以载货5000吨计算，不管使用船吊还是岸吊，在设备完善的港口内，每天每个舱口可卸载200－500吨的货物，4－6个工作日完全卸空。
+He was now in command of the entire fleet's unloading operation. This was not only because he had arranged the loading, but also because loading and unloading a general cargo ship is a highly technical job. For a 10,000-ton general cargo ship carrying 5,000 tons of cargo, whether using ship cranes or shore cranes, in a well-equipped port, 200-500 tons of cargo can be unloaded per hatch per day, and the ship can be completely emptied in 4-6 working days.
 
-　　蒙德因为知道穿越者们即没有实际经验，在力气和技术上也无法和码头搬运工人相媲美，所以在装货的时候就不惜多花包装费用，各种件杂货全部包装成成组货物。
+Because Meng De knew that the transmigrators had no practical experience and could not compare with dockworkers in terms of strength and skill, he had not spared any expense on packaging during loading. All kinds of general cargo were packaged into consolidated units.
 
-　　所谓成组货物，常见的例子就是集装箱，但是丰城轮因为尺寸限制和港口设备的问题——在一个毫无专业装卸设备的港口吊运集装箱是一件富有挑战性的事情，丰城轮上只少量搭载一些集装箱。
+A common example of consolidated cargo is the container, but due to the size limitations of the *Fengcheng* and the lack of port equipment—lifting containers in a port with no professional loading and unloading equipment is a challenging task—only a small number of containers were carried on the *Fengcheng*.
 
-　　杂货轮最常用的成组货物就是使用货物托盘、网络袋、集装袋（包）等成组的承载工具将零散的件杂货和散货组集合成组，虽然没有集装箱那么多的优点，还是大大方便了各种散杂货的装卸。
+The most commonly used consolidated cargo for general cargo ships is the use of pallets, net bags, and bulk bags to group scattered general cargo and bulk goods. Although not as advantageous as containers, it still greatly facilitates the loading and unloading of various bulk and general cargo.
 
-　　丰城轮上有4组吊杆，8台起货机，起货重量分别为3－5－10吨，其中一台为60吨级的重吊。起吊多数货物都没问题。开动吊机也是项技术活，幸亏有了三个月的海员实习，总算没见猪肉也看过猪跑，七七八八的把吊机都开动起来，就是动作迟缓僵硬，来来回回的晃动了好几次，把甲板上排队下船的穿越者吓得不轻，都躲着吊杆跑，一时间秩序大乱，任杜雯在高音喇叭里如何的“发扬革命英雄主义，一不怕死，二不怕苦”也没奏效。
+The *Fengcheng* had 4 sets of derricks and 8 winches, with lifting capacities of 3, 5, and 10 tons, including one 60-ton heavy-lift derrick. Lifting most of the cargo was not a problem. Operating the cranes was also a skilled job. Fortunately, thanks to the three months of sailor internship, even if they hadn't eaten the pork, they had seen the pig run. They managed to get all the cranes running, albeit slowly and stiffly. The cranes swung back and forth several times, scaring the transmigrators queuing to disembark on the deck. They all dodged the cranes, and for a time, the order was chaotic. No matter how much Du Wen shouted about "carrying forward the revolutionary heroic spirit, fearing neither hardship nor death" over the loudspeaker, it had no effect.
 
-　　折腾了差不多十分钟，第一个货物托盘在空中吊半天才算着落在浮码头上，惊魂未定的穿越者们都不吝惜掌声，叫好声一片。
+After about ten minutes of fumbling, the first cargo pallet was finally lowered onto the floating pier after hanging in the air for a long time. The transmigrators, still shaken, did not spare their applause, and cheers erupted.
 
-　　掌声过了还没有15分钟，船上的人就都傻眼了——吊机手只顾着把货物往浮码头上卸，片刻功夫把吊杆下的码头空间全占满了，排队下船的人下不去不说，最要命的忘记把捆在甲板上的一台3吨和一台10吨东方红叉车先吊下去。吊运下去货盘每个都在1吨以上，下面的人即拽不动，又吊不起来。
+Less than 15 minutes after the applause, the people on the ship were all dumbfounded. The crane operators had only been focused on unloading the cargo onto the floating pier. In a short time, they had completely filled the pier space under the cranes. Not only could the people queuing to disembark not get down, but most fatally, they had forgotten to first lower the 3-ton and 10-ton Dongfanghong forklifts that were strapped to the deck. The pallets that had been lowered each weighed over a ton. The people below could neither drag them nor lift them.
 
-　　这下热闹起来，蒙德在甲板上跑来跑去，一脑门子汗，这下执委会又给他添加了一把刀，打回原型了。
+Now it was a real mess. Meng De ran back and forth on the deck, his forehead covered in sweat. The Executive Committee had just added another blade to his name, and now he was back to square one.
 
-　　[马千瞩][y005]脑筋一转，命令先把登陆艇调来，把叉车吊登陆艇上，先把叉车送上岸，再从岸上绕回到浮码头上，这么一个圈子兜下来才算解决了前后流程错误导致的卸货堵塞。
+[Ma Qianzhu][y005]'s mind turned. He ordered the landing craft to be brought over, the forklifts to be loaded onto it, and ferried to the shore first. Then they would drive back to the floating pier from the shore. This roundabout solution finally solved the unloading blockage caused by the procedural error.
 
-　　卸货部门重新设计了卸货路线，在栈桥上绘上了不同箭头的方向车道，保证同时一车来一车去，大大提高了卸货的效率。这样的安排就和国内的马路一样，彻底无视行人的基本权益——谁也不敢在那狭窄漂浮的栈桥上去和叉车抢路，更不用说还有十多辆出口越南的柴油动力小型农用车正在上面来回行驶，发挥出其皮实耐用、超载能力更是一流的特征：在摇摇晃晃的浮桥上、在砾石遍地的沙滩上整日的奔走。那几天在海滩上开过农用车的穿越众，后来都特许在制服袖子上绣上一枚袖标：“农用车一次突击章”。
+The unloading department redesigned the unloading route, painting directional lanes with different arrows on the jetty to ensure that one vehicle could come and one could go at the same time, greatly improving the unloading efficiency. This arrangement was just like the roads in China, completely ignoring the basic rights of pedestrians—no one dared to compete with the forklifts for the road on the narrow, floating jetty. Not to mention, there were more than a dozen small diesel-powered farm vehicles, originally destined for export to Vietnam, driving back and forth on it, demonstrating their rugged durability and superb overloading capacity, running all day on the swaying floating bridge and the gravel-strewn beach. The transmigrators who drove the farm vehicles on the beach those few days were later specially permitted to embroider a patch on the sleeves of their uniforms: the "Farm Truck Assault Badge."
 
-　　董时叶随着大流抖抖筛筛的从绳网上爬下来，换上小艇，终于脚踏实地的爬上了岸，一时间头晕目眩地跟着去了登记点登记寄存背包，扫描完ID卡，就发到伐木斧一把，这玩意又大又沉，握手里都不知道该怎么拿，干脆学矮人的样子扛在肩膀上。
+Dong Shiye, following the crowd, trembled as he climbed down the rope net, transferred to a small boat, and finally set foot on solid ground. For a moment, he felt dizzy. He followed the others to the registration point to register and store his backpack. After his ID card was scanned, he was issued a felling axe. This thing was big and heavy. He didn't even know how to hold it and ended up carrying it on his shoulder like a dwarf.
 
-　　被分到伐木的几个组都有点不知所措，拿到的工具更是五花八门，从大片锯、伐木斧到船上的消防斧，五花八门啥都有，就是没一个人知道到底该怎么拿的。
+The few groups assigned to logging were all at a loss. The tools they received were a motley collection, from large saws and felling axes to fire axes from the ship. There was a bit of everything, but not a single person knew how to actually use them.
 
-　　正不知所措间，登记处来一个彪形大汉，脚穿一双黑色军用长统胶靴，一手里提着一个大号旅行袋，一手一柄大斧子，威风凛凛地走了过来。
+While they were at a loss, a burly man came from the registration office. He wore a pair of black military-style high-top rubber boots, carried a large travel bag in one hand, and a large axe in the other. He walked over majestically.
 
-　　“弟兄们，”他吼了一嗓子，“我叫吴旷明，木材组的组长。大伙都跟我来。”
+"Brothers," he roared, "My name is Wu Kuangming, the leader of the Lumber Group. Everyone, follow me."
 
-　　执委会登陆后派出了第二波由军事组和农林人员组成的资源勘探队，对河口地区的进行了勘察，结论是这里的木材资源十分匮乏。海岸旁有一些高大乔木，出于防风固沙的考虑，这样的天然林不宜砍伐。沿河深入一些，发现文澜河两岸很少成片的成年乔木林，小杂树林到处可见，但基本没有成材的，除了烧火搭棚子之外没什么用。
+After landing, the Executive Committee had dispatched a second wave of resource exploration teams composed of military group and agriculture and forestry personnel to survey the estuary area. The conclusion was that the timber resources here were very scarce. There were some tall trees along the coast, but for the sake of windbreak and sand fixation, such natural forests should not be cut down. Further up the river, they found that there were few mature forests along the banks of the Wenlan River. Small, miscellaneous groves were everywhere, but they were basically not suitable for timber and were only useful for firewood and building sheds.
 
-　　最后还是决定砍伐河口处红树林中的乔木。河口和海湾沿岸的红树林相当的茂密，而且植被齐全，从灌木、小乔木到大型乔木应有尽有。特别是在河口地区边缘，靠近沙滩的地方有成片的10米以上的海莲林，砍伐难度比较小。于是第一个伐木场就设在这里。
+In the end, they decided to cut down the tall trees in the mangrove forest at the estuary. The mangrove forest along the estuary and the bay was quite dense, with a complete range of vegetation, from shrubs and small trees to large trees. Especially at the edge of the estuary, near the sandy beach, there were patches of *Bruguiera sexangula* trees over 10 meters tall, which were relatively easy to cut down. So, the first logging site was set up here.
 
-　　说是采伐难度较小，其实也得走进半沼泽化的红树滩涂上，一小片一小片的沙洲纵横在水里，上面长着各式各样的红树林植物，枝叶缠绕，还散发出一股霉烂的臭味。让大伙看着真有点望而却步。
+Although it was said to be relatively easy to harvest, they still had to walk into the semi-swampy mangrove flats. Small sandbars crisscrossed the water, covered with various mangrove plants. The branches and leaves were entangled, and there was a musty, rotten smell, which made everyone a little hesitant.
 
-　　吴旷明叫人抬了几箱子长统雨靴过来，吩咐大家都换上。
+Wu Kuangming had someone bring over several boxes of high-top rain boots and ordered everyone to put them on.
 
-　　“一会我们就进去伐木了。大家要小心了。”他叮嘱大家，“千万不要深入树林，里面的没有道路的，你掉到潮沟里喊救命我们都不知道你在哪！”
+"We'll be going in to log in a moment. Everyone, be careful," he instructed. "Absolutely do not go deep into the forest. There are no paths inside. If you fall into a tidal creek, we won't even know where you are to shout for help!"
 
-　　说着带队淌着水过去了，他站在一棵海莲树旁，手里拿着斧子对着大伙说：“树是好东西，玩过帝国的都知道——你说你只玩星际和红警？那你跟着我们过来干什么？赶快跳海里游回去。砍树要注意，要斜着挥斧，先从上面向下，然后从下面向上——树倒的时候一定要喊一声。砍树的时候要时时刻刻听别人的招呼！自己别给树压了——把你脑壳槌破了一命呜呼倒好了，别伤了腰脊闹个半身不遂，这新世界的第一张残疾证可就归你了。我现在去拿绳子，等一下教大家如何用绳子拖木头。”
+With that, he led the team wading through the water. He stood next to a *Bruguiera* tree, holding an axe, and said to the crowd, "Trees are good things. Anyone who has played Age of Empires knows that—what, you only play StarCraft and Red Alert? Then what are you doing here with us? Hurry up and jump into the sea and swim back. When you cut a tree, be careful. You need to swing the axe at an angle, first from top to bottom, then from bottom to top. When the tree is about to fall, you must shout! When you are cutting a tree, you must always listen for others' shouts! Don't get crushed by a tree yourself—if it smashes your head and you die, that's one thing. But don't injure your spine and end up paralyzed. The first disability certificate of this new world will be yours. I'm going to get some rope now. I'll teach you all how to drag the logs with ropes later."
 
-　　吴旷明走到计委的办公点，请他们调拨一捆缆绳和一些挂钩去树林。这边建筑组的人已经在砍伐点不耐烦地等待着新的木材。
+Wu Kuangming went to the Planning Commission's office point and asked them to allocate a coil of rope and some hooks to the forest. Over here, the people from the construction group were already waiting impatiently for the new timber at the felling site.
 
-　　“什么时候才能有木材？”那个叫卓天敏的家伙似乎很着急的样子。三十多岁年纪，白白净净和和气气，一看就是养家糊口的居家男人，不大象个搞建筑的工头。
+"When will we get the wood?" The guy named Zhuo Tianmin seemed very anxious. He was in his thirties, fair-skinned and gentle, looking like a family man trying to make a living, not much like a construction foreman.
 
-　　“急什么，现在连给集装箱上岸用的滚木都没凑够数呢。你以为在打帝国时代，鼠标一点我们挥挥斧子就加＋10木材了？”
+"What's the rush? We haven't even gathered enough logs to use as rollers to get the containers ashore yet. Do you think this is Age of Empires, where we just click the mouse and swing our axes and get +10 wood?"
 
-　　“应该是＋12木材，你刚升级了缆绳科技，哈哈……”伐木组的人一起哄笑起来。
+"It should be +12 wood. You just upgraded the rope technology, haha..." The logging group burst into laughter.
 
-　　“老子有＋100木材的科技。”他从那旅行袋里变戏法似的掏出一把德州电锯狂使的大功率油锯满腔豪迈的一拽，突突的马达声中连续喷着青烟。吴旷明狞笑着走近一棵大树，狠狠地挥了下去。
+"I have +100 wood technology," he said. He magically pulled out a large, powerful chainsaw, the kind used in Texas Chainsaw Massacre, from his travel bag, gave it a heroic pull, and with a roar of the motor, it began to spew blue smoke. Wu Kuangming grinned savagely, approached a large tree, and swung down hard.
 [y005]: /characters/y005 "马千瞩"
