--- a/_posts/2009-10-27-2-01000.md
+++ b/_posts/2009-10-27-2-01000.md
@@ -1,107 +1,107 @@
 ---
 layout: post
-title: 第十节 意外的偷渡者
+title: "Section 10: The Unexpected Stowaway"
 category: 2
 path: 2009-10-27-2-01000.md
 tag: [normal]
 ---
 
-　　“B座？”柳正想这倒稀罕了，虽然他不知道这个营地是什么模样，但肯定不会是一栋大楼，还分A座B座？
+"Building B?" Liu Zheng thought that was strange. Although he didn't know what this camp looked like, it certainly wouldn't be a large building divided into Building A and Building B.
 
-　　整个营地规划的倒是整整齐齐，棋盘格式的帐篷营房。为了防潮，地面都用沙土垫高了一层，四周还洒了一层石灰和雄黄——用来驱蛇虫。
+The entire camp was planned out neatly, with tents arranged in a grid pattern. To prevent dampness, the ground was raised with a layer of sand, and a layer of lime and realgar was sprinkled around to repel snakes and insects.
 
-　　根据路口的营地表示牌，他很快就找到了自己的帐篷位置。原来所谓的A座B座就是男单身区和夫妻家庭区的区别。两区之间有一条道路间隔，灯火通明。
+Following the camp sign at the intersection, he quickly found his tent's location. It turned out that the so-called Building A and Building B were just the distinctions for the male singles' area and the couples/family area. A road, brightly lit, separated the two areas.
 
-　　“不错，考虑得还蛮周到。”柳正可是带老婆来的，要是劳动一天之后还要过男女分居的日子这未免太无聊了。他忽然皱了下眉，“什么味？”
+"Not bad, they've considered things quite thoughtfully." Liu Zheng had brought his wife along. It would be too boring to live separately after a long day of labor. He suddenly frowned. "What's that smell?"
 
-　　营地还弥漫着一股怪味——这是卫生组喷洒的用来驱逐蛇虫的农药夹杂着正在燃烧的艾草的气味。更令他不满的是，营地的通道里已经挂上了“禁止吸烟！”的告示。柳正此刻最想干的事情就把背包里那条555拿出来抽上几口。
+The camp was filled with a strange odor—a mixture of the pesticide sprayed by the health group to repel snakes and insects and the smell of burning mugwort. What dissatisfied him even more was that "No Smoking!" signs had already been hung up in the camp's passages. The thing Liu Zheng wanted to do most at this moment was to take out the carton of 555 cigarettes from his backpack and have a few puffs.
 
-　　他的背包里好东西可不少，野营装备、各国军队野战口粮应有尽有——柳正并不太信得过执委会的后勤保障能力，再说即使有食堂，这类公共食堂一般都是效率差味道差的双差典型。开始几天肯定是吃干粮的，还是自己动手，丰衣足食吧。
+He had quite a few good things in his backpack: camping gear, military field rations from various countries—Liu Zheng didn't quite trust the Executive Committee's logistical support capabilities. Besides, even if there was a cafeteria, such public canteens were typically a model of both poor efficiency and poor taste. For the first few days, they would definitely be eating dry rations. It was better to rely on himself for food and clothing.
 
-　　在红树林砍伐的时候，他就已经用细藤条给自己编了几个网袋。红树林是生物的乐园，鱼虾螃蟹之类相当多。趁着几次休息的时间，他摸了斤把虾，还逮了一只螃蟹，用藤条捆好了，准备晚上和老婆打牙祭。
+While logging in the mangrove forest, he had already woven several net bags for himself out of thin vines. The mangrove forest was a paradise for living creatures, with an abundance of fish, shrimp, and crabs. During a few breaks, he had caught about a pound of shrimp and a crab, which he had tied up with vines, preparing for a feast with his wife at night.
 
-　　路边的帐篷外，三三两两的穿越者们就着水啃着干粮——看来食堂没戏么，也有人实在太累，已经在帐篷里鼾声如雷了。
+Outside the tents along the road, transmigrators were eating dry rations with water in small groups—it seemed the cafeteria was a no-go. Some people were too tired and were already snoring loudly in their tents.
 
-　　正走着路，以冉耀为首的几个军事组成员点着火把押着一个脑袋上扣着黑塑料袋的人走过来拦住了他。
+As he was walking, several members of the military group led by Ran Yao, holding torches, came over with a person with a black plastic bag over their head and stopped him.
 
-　　“夜间检查，出示你的ID卡。”冉耀的声音让柳正不由得又想起了他当年在北京的日子。
+"Night inspection. Show me your ID card." Ran Yao's voice involuntarily reminded Liu Zheng of his days in Beijing.
 
-　　他递上ID卡，扫描器很快在PDA上显示出了他的ID号。
+He handed over his ID card. The scanner quickly displayed his ID number on the PDA.
 
-　　“你是柳正？”
+"Are you Liu Zheng?"
 
-　　“是啊，是我。”柳正有点迷惑，难道这里要查暂住证吗？还是执委会有什么事情要找他。
+"Yes, that's me." Liu Zheng was a little confused. Did they need to check for temporary residence permits here? Or did the Executive Committee have some business with him?
 
-　　“你带了外军的野战口粮？”
+"Did you bring foreign military field rations?"
 
-　　“对啊。”柳正想这是不是要征用啊，这可不行。
+"Yes, I did." Liu Zheng thought they might be requisitioning them, which would not be acceptable.
 
-　　“什么牌子的，多少数量？”
+"What brand, and how many?"
 
-　　“那哪能记得清啊。我想想，MRE的四号、七号、八号……”
+"How could I remember that clearly? Let me think, MREs number four, seven, eight..."
 
-　　“好了，”冉耀打断了他，和周围的军事组员对视了一下，从手中的包里翻出了四五包褐色塑料胶袋，还有一条555。柳正一眼就看出，这正是自己带的储备物资，那条香烟他还特别贴了个标签在封口上。
+"Alright," Ran Yao interrupted him and exchanged a look with the surrounding military group members. He pulled out four or five brown plastic bags from the bag in his hand, along with a carton of 555s. Liu Zheng recognized at a glance that these were the reserve supplies he had brought. He had even put a special label on the seal of the cigarette carton.
 
-　　“我的烟！”
+"My cigarettes!"
 
-　　“这是我们从这家伙手上查到的，”冉耀示意了一下，“他正从你的帐篷里出来。”
+"We found these on this guy," Ran Yao gestured. "He was just coming out of your tent."
 
-　　“啊！”柳正做梦也没想到，穿越第一天就有人偷东西。人性啊人性，太丑恶了！
+"Ah!" Liu Zheng had never dreamed that someone would steal things on the first day of the transmigration. Humanity, oh humanity, so ugly!
 
-　　“我们也没想到，原来觉得执委会要军事组在营地内巡逻是多此一举，没想到第一天就抓了一个现行。”
+"We didn't expect it either. We originally thought it was overkill for the Executive Committee to have the military group patrol within the camp. We didn't expect to catch someone in the act on the first day."
 
-　　“这家伙怎么处理？”
+"What do we do with this guy?"
 
-　　“我们不管，执委会去处理吧。”冉耀笑了一下，“要搁在21世纪这点案值也就教育一下放人，最多拘留二天的。”
+"That's not our business. Let the Executive Committee handle it." Ran Yao smiled. "If this were the 21st century, for a crime of this value, he'd just get a lecture and be released, or at most be detained for two days."
 
-　　看着这群人渐渐远去，拿着烟的柳正不由得同情起这个倒霉的家伙来，刚来就要留下污点，太惨了。他连去海边抽烟的兴趣都没有了。
+Watching the group walk away, Liu Zheng, holding his cigarettes, couldn't help but feel sorry for the unlucky guy. To get a black mark on his record right at the beginning was too tragic. He even lost the interest to go to the seaside for a smoke.
 
-　　冉耀把人带到指挥部，想先问问情况再汇报给执委会发落。刚才抓到的这个人，除了偷窃之外，身上还有太多的疑点。
+Ran Yao took the man to the command post, intending to question him first before reporting to the Executive Committee for a decision. The man they had just caught had too many suspicious points besides the theft.
 
-　　在拘捕他的时候，此人试图抵抗，虽然迅速被制服，但是明显有拳脚的功底，搜身搜出一支64式手枪，这可不是化隆造，而是有枪号的正货。冉耀很清楚，真正的64手枪在黑枪市场上并不多见。有些穿越众有渠道有能力去搞枪枝，但他决不会去搞一支有小砸炮之称的64式手枪。
+When they arrested him, the man had tried to resist. Although he was quickly subdued, he clearly had some martial arts skills. A body search revealed a Type 64 pistol, not a crude homemade one, but a genuine article with a serial number. Ran Yao knew very well that genuine Type 64 pistols were not common on the black market. Some transmigrators had the channels and ability to get firearms, but they would never go for a Type 64 pistol, known for its weak power.
 
-　　在灯光下把头罩一掀掉，这个疑团就更大了。眼前的这个男人，乍看起来年纪轻轻，普通的长相，但是眼神颇为精明老练——冉耀熟悉这样的目光——应该是个同行啊。穿越者里的警察同行寥寥无几，他都认得，这个从来没见过。再联系到的那支64手枪……
+When they took off the hood under the light, the mystery deepened. The man before them looked young at first glance, with ordinary features, but his eyes were sharp and experienced. Ran Yao was familiar with such a gaze—he should be a colleague. There were very few police colleagues among the transmigrators, and he knew them all. He had never seen this one before. And then there was that Type 64 pistol...
 
-　　衣服，是穿越者统一的热带作训服，戴着一个基本劳动力的臂章，但是没有电子狗牌。
+His clothes were the standard tropical training uniform of the transmigrators, and he wore a basic laborer's armband, but he had no electronic dog tag.
 
-　　“姓名，年龄，职业？”冉耀随意地问道，“你的ID卡呢？”
+"Name, age, occupation?" Ran Yao asked casually. "Where is your ID card?"
 
-　　年轻人低头不语，冉耀虽然没干过预审，但是见过的犯人多了，什么样的表情做派的都有，就是没见过这样的——极度的迷惑。
+The young man lowered his head and said nothing. Although Ran Yao had never conducted an interrogation, he had seen many criminals. He had seen all kinds of expressions and attitudes, but never one like this—extreme confusion.
 
-　　良久，他才开口了，反问了一句，“你是谁？”
+After a long time, he finally spoke, asking a question in return, "Who are you?"
 
-　　冉耀一愣，自从上次勇救[文总][y002]之后，穿越者里不认识他的人真还不多。
+Ran Yao was taken aback. Since he had bravely rescued [Director Wen][y002], there were very few transmigrators who didn't know him.
 
-　　“我是冉耀，治安小组组长。”
+"I am Ran Yao, leader of the Public Security Group."
 
-　　“治安小组，什么地方的治安小组？”郭逸把他上上下下地打量了半天，刚才就是这家伙带人扑上来的。的确是公安武警系统的擒拿拳，气质也很象——同类总是容易识别同类的——一个警察怎么也穿着穿越公司发的衣服？他怎么会在船上？
+"Public Security Group? The Public Security Group of where?" Guo Yi sized him up and down. This was the guy who had led the charge to tackle him just now. It was indeed the takedown technique of the public security or armed police system, and his demeanor was also very similar—it's always easy to recognize one of your own. Why was a policeman also wearing the clothes issued by the Transmigration Company? How did he get on the ship?
 
-　　疑问一个接一个，不过对郭逸来说，从昨天到今天，疑问已经够堆成山了。
+Questions piled up one after another, but for Guo Yi, from yesterday to today, the questions had already piled up into a mountain.
 
-　　原来郭逸和二个美国特工知道船的去向之后，一路追踪到港口，令他们失望的是，船上的货物并没有什么特殊的，都是这里的港务公司装载的。拿到货物清单之后三个人研究了半天也没研究出[文德嗣][y002]有什么目的。但他们在监视中发现，[文德嗣][y002]带人上了那丰城轮。商量之后，三个人干脆来个卧底侦察。按上船的人行头，每人置备了一身，通过港务局的协助偷偷上了船，混在船上躲了起来。这事情，船上的高级船员是知道的，为了防备万一，他还通知了上级部门自己的行动方案。
+It turned out that after Guo Yi and the two American agents knew the ship's destination, they had tracked it to the port. To their disappointment, the cargo on the ship was nothing special; it was all loaded by the local port services company. After getting the cargo list, the three of them studied it for a long time but couldn't figure out [Wen Desi][y002]'s purpose. But during their surveillance, they discovered that [Wen Desi][y002] had boarded the *Fengcheng* with his people. After discussion, the three of them decided to go undercover. They got themselves similar outfits to the people boarding the ship, and with the help of the port authority, they secretly boarded the ship and hid. The senior crew members of the ship knew about this. To be on the safe side, he had also notified his superiors of his action plan.
 
-　　事情的发展出乎意料，当晚薛子良发现那艘有军火走私嫌疑的帆船果然与丰城轮汇合的时候，他还以为立功的机会到了，正激动万分的忙着拨手机汇报的时候，信号突然就中断了。
+The development of events was unexpected. That night, when Xue Ziliang discovered that the sailboat suspected of arms smuggling had indeed rendezvoused with the *Fengcheng*, he thought his chance for glory had arrived. Just as he was excitedly dialing his phone to report, the signal suddenly cut out.
 
-　　随后的一夜一天，这三个人在惶恐中渡过：先是谁的手机也拨不通，连薛子良花大钱租的海事卫星电话也没有信号，接着天亮之后，郭逸发现船到了一个完全陌生的荒凉地方。
+For the next night and day, the three of them spent their time in panic. First, no one's mobile phone could get a signal, not even Xue Ziliang's expensive satellite phone. Then, after dawn, Guo Yi found that the ship had arrived at a completely unfamiliar and desolate place.
 
-　　三个人都认为船是到了越南的某个荒僻的岛屿港湾里——从船只的航速和周边地理环境分析这是有可能的，但是海事卫星电话还是打不通。不是有干扰，是干脆一点信号都没有——根本无法解释的现象。
+The three of them all believed that the ship had arrived at some remote island harbor in Vietnam—this was possible based on the ship's speed and the surrounding geographical environment. But the satellite phone still couldn't get a signal. It wasn't interference; there was simply no signal at all—an inexplicable phenomenon.
 
-　　看着船开始下客卸货，为了探查明白，郭逸干脆混到了排队下船的人群里，在混乱中拿了一个基本劳力的袖标。谁也没发现海滩上多了一个没有组别的人。军事组的警戒线设置在外围，压根没想到船上还有奸细。他就这样在营地里晃荡了一天，直到肚子饿了，才想起搞点吃的带回去。没想到一得手就给人抓了现行，虽说是工作需要，但是日后给同事们知道了还不笑掉大牙。
+Seeing the ship begin to disembark passengers and unload cargo, in order to find out what was going on, Guo Yi simply mixed into the crowd queuing to get off the ship and grabbed a basic laborer's armband in the chaos. No one noticed that there was an extra person without a group on the beach. The military group's security perimeter was set up on the outskirts, and they never imagined there was a spy on the ship. He wandered around the camp like this for a day, until he got hungry and thought of getting something to eat to take back. He never expected to be caught in the act. Although it was for work, if his colleagues found out about it later, they would laugh their heads off.
 
-　　“执委会，内务民政委员会治安组！有问题吗？”
+"Executive Committee, Internal and Civil Affairs Committee, Public Security Group! Any problem?"
 
-　　郭逸抬起了头，他根本没明白冉耀说的是什么，但是这个机构明显不属于中华人民共和国。难道是某个犯罪组织？
+Guo Yi raised his head. He didn't understand what Ran Yao was saying at all, but this organization clearly did not belong to the People's Republic of China. Could it be some criminal organization?
 
-　　冉耀已经基本肯定：此人不是穿越众。想起昨晚被虫洞吸进来的一家人，难道这人也是？但他明显是有目的有针对性而来的。从偷袖标混到营地里的表现看，此人不是无辜的卷入者。
+Ran Yao was now almost certain: this person was not a transmigrator. He thought of the family that had been sucked in by the wormhole last night. Could this person be one of them too? But he had clearly come with a purpose and a target. From his actions of stealing an armband and sneaking into the camp, he was not an innocent victim.
 
-　　“好吧，我都回答你了，你是谁，混到我们当中来做什么？”
+"Alright, I've answered you. Who are you, and what are you doing sneaking among us?"
 
-　　郭逸坚决的不说话。他愈发认为这些人是十分凶残的有组织犯罪分子。今天一整天的见闻里，他看到许多专业人员在工作，卸下了大量设备和机械，担任警戒的人装备精良，而且许多人是军人出身，再加这个审问他的同行……
+Guo Yi remained resolutely silent. He became more and more convinced that these people were extremely ruthless organized criminals. From what he had seen and heard all day, he saw many professionals at work, unloading a large amount of equipment and machinery. The guards were well-equipped, and many were ex-military. And then there was this colleague interrogating him...
 
-　　这个犯罪团伙的能量也太大了吧！从美国走私武器，在越南造基地，雇佣退伍军人和警察……郭逸不寒而栗，完了，自己落在这伙人手里，肯定会备受严刑拷打，最后悲惨的死去。虽然小郭一上班就知道，他的工作的性质随时可能让他成为烈士，但是成为烈士的人毕竟是少数，几年也不会出一二个。再说烈士生前也不知道自己就一定会壮烈牺牲，这可比现在他等着做烈士好受多了。
+The power of this criminal gang was too great! Smuggling weapons from the United States, building a base in Vietnam, hiring demobilized soldiers and police... Guo Yi shivered. It was over. He had fallen into the hands of this group. He would definitely be severely tortured and die a miserable death. Although Little Guo knew from the day he started his job that its nature could make him a martyr at any time, martyrs were, after all, a minority, with only one or two every few years. Besides, a martyr doesn't know beforehand that they will die heroically, which is much better than him waiting to become a martyr now.
 
-　　坚决不屈服，受党多年教育的小郭一面坚定自己，一面继续不说话，拷打就拷打吧，现在只希望两个傻乎乎的美国佬能逃出去，这样多少还有获救的希望，就不知道他们有没有美国电影里那么神勇。
+*Resolutely do not yield.* Little Guo, educated by the Party for many years, strengthened his resolve and continued to remain silent. *Torture me if you want.* Now he only hoped that the two foolish Americans could escape. That way, there would still be some hope of rescue. He just didn't know if they were as heroic as they were in American movies.
 
-　　冉耀知道他有点恐惧了，这是人之常情。但他对自己的职责看得很重，坚决不说话——这倒有点麻烦。逼供显然是不行的。即使他别有用心的混上船，在这个时空也只能成为同伴了。解释吗？冉耀实在不知道该怎么去说明，会被当成精神病吧？今天[萧子山][y001]花了一个下午给那一家人在解释他们的环境，除了挨了无数川味国骂之外没说服任何人。
-[y001]: /characters/y001 "萧子山"
+Ran Yao knew he was a little scared; that was only human. But he took his own duty very seriously and resolutely refused to speak—this was a bit troublesome. Torture was obviously not an option. Even if he had ulterior motives for sneaking onto the ship, in this time-space, he could only become a companion. Explain? Ran Yao really didn't know how to explain it. Would he be treated as a mental patient? Today, [Xiao Zishan][y001] had spent a whole afternoon explaining their situation to that family, and besides receiving countless Sichuan-flavored curses, he hadn't convinced anyone.
+[y001]: /characters/y001 "Xiao Zishan"
 [y002]: /characters/y002 "文德嗣"
