--- a/_posts/2009-10-28-2-01100.md
+++ b/_posts/2009-10-28-2-01100.md
@@ -1,179 +1,181 @@
 ---
 layout: post
-title: 第十一节 说服
+title: "Section 11: Persuasion"
 category: 2
 path: 2009-10-28-2-01100.md
 tag: [normal]
 ---
 
-　　双方互相沉默着，冉耀仔仔细细地看着这个人，他忽然有了发现，此人的袖口上擦着一丝不引人注目的红色痕迹，他猛得把胳膊拽了起来。郭逸一惊，刚想挣扎，就被身边的人压了下去。
+They stared at each other in silence. Ran Yao examined the man carefully and suddenly noticed something. There was an inconspicuous red mark on the man's cuff. He abruptly grabbed his arm. Guo Yi was startled and was about to struggle, but he was immediately pinned down by the people around him.
 
-　　冉耀用指甲刮了一下痕迹，凑到鼻端闻了一闻，脸上露出了莫名的笑意：
+Ran Yao scraped the mark with his fingernail, brought it to his nose, and sniffed. A strange smile appeared on his face.
 
-　　“还有个女人。”这是口红的擦痕。
+"There's a woman." It was a lipstick smear.
 
-　　他命令手下，“向执委会汇报，船上有偷渡客，已抓获一人，船上至少还有一名女性！”他又补充了一句，“对方可能持有武器！”
+He ordered his subordinate, "Report to the Executive Committee. There are stowaways on the ship. One has been captured. There is at least one more female on board!" He added, "The other party may be armed!"
 
-　　“是！”
+"Yes, sir!"
 
-　　“通知何鸣和邬德，在营地和船只上全面排查！检查所有人的ID卡，没有卡的人一律拘押到丰城轮上鉴别。”
+"Notify He Ming and Wu De to conduct a full search of the camp and ships! Check everyone's ID cards. Anyone without a card is to be detained on the *Fengcheng* for identification."
 
-　　事情很快就随着大规模的排查水落石出了。丰城轮上军事组一个舱一个舱的检查。地毯式搜查的结果就是二个ATF的特工在靠近底舱的一个杂物舱内被揪了出来——已经一天没吃的特工在明晃晃的SKS步枪刺刀下没打算表现其神勇，而是乖乖的束手就擒了。
+The matter was quickly cleared up with a large-scale search. The military group on the *Fengcheng* checked cabin by cabin. The result of the carpet search was that the two ATF agents were dragged out of a storage compartment near the bottom of the ship. The agents, who hadn't eaten for a day, had no intention of showing their heroism in the face of gleaming SKS rifle bayonets and surrendered obediently.
 
-　　两个ATF特工倒是很配合，很快就把他们追查北美分舵买枪运枪再一直追查到国内的经过都说了出来。薛子良企图和冉耀谈判，提出如果他可以帮忙联系美国领事馆或者其他办法帮他们脱身，可以支付给他一大笔报酬。
+The two ATF agents were very cooperative. They quickly recounted their investigation, from tracking the North American branch's gun purchases and shipments to following the trail back to China. Xue Ziliang tried to negotiate with Ran Yao, proposing that if he could help them contact the US consulate or find some other way to get them out, he would be paid a large reward.
 
-　　冉耀笑着摇摇头：“价码很不错，但是没人有本事拿。”
+Ran Yao just shook his head with a smile. "The price is very good, but no one has the ability to collect it."
 
-　　“你害怕？”薛子良耸了耸肩，“美国政府可以保护你……”
+"Are you afraid?" Xue Ziliang shrugged. "The US government can protect you..."
 
-　　“我相信美国政府的能力，问题是眼下没有这玩意。”
+"I believe in the capabilities of the US government. The problem is, that entity doesn't exist right now."
 
-　　薛子良吹了一下口哨：“好吧好把，我知道这里是中国政府的地盘。”他狡黠的一笑，“说不定不是。”
+Xue Ziliang whistled. "Alright, alright, I know this is the territory of the Chinese government." He gave a sly smile. "Or maybe it's not."
 
-　　“你知道今天是几号么？”
+"Do you know what day it is today?"
 
-　　“20XX年X月X号。”
+"Month X, Day X, 20XX."
 
-　　“错了，今天是公元1628年，中国农历九月初一。”冉耀摇头，“你来到了另一个时空。”
+"Wrong. Today is the first day of the ninth lunar month in the year 1628 AD," Ran Yao said, shaking his head. "You have arrived in another time-space."
 
-　　两个美国佬象看一个精神病一样地望着他，继而神秘莫测的微笑起来。
+The two Americans looked at him as if he were a mental patient, then smiled mysteriously.
 
-　　“我就知道。”冉耀怨念的自言自语道，这个反应完全在他意料之中。
+"I knew it," Ran Yao muttered to himself with resentment. This reaction was completely within his expectations.
 
-　　船上的执委会会议室里，从三个偷渡客身上搜出来的东西摊了一桌子。护照、证件、文件、手枪……七零八散的东西摊了一桌子。两个ATF的东西更多，满满二背包，但是没有食物——大概觉得不会在船上呆很久。
+In the Executive Committee's conference room on the ship, the items confiscated from the three stowaways were spread out on a table. Passports, IDs, documents, pistols... a whole table of miscellaneous things. The two ATF agents had even more stuff, two full backpacks, but no food—they probably thought they wouldn't be on the ship for long.
 
-　　“这就是传说中的X处啊。”[文德嗣][y002]拿起郭逸的证件，翻了翻。
+"So this is the legendary Section X," [Wen Desi][y002] said, picking up Guo Yi's credentials and flipping through them.
 
-　　“这个郭逸什么也不肯说，很守纪律。”冉耀还不忘夸他。
+"This Guo Yi refuses to say anything. Very disciplined," Ran Yao couldn't help but praise him.
 
-　　“两个美国佬呢？”
+"What about the two Americans?"
 
-　　“都说了，是来追查北美那帮人来的，就这么着和小郭搭一块了。”
+"They've told us everything. They were here to investigate the North American guys and just happened to team up with Little Guo."
 
-　　“他们来干什么已经没意义了，反正也回不去了。”[萧子山][y001]说，“还是说怎么处理吧。”
+"What they came here for is meaningless now. They can't go back anyway," said [Xiao Zishan][y001]. "Let's talk about how to handle them."
 
-　　“你说处理这词有点‘解决’的意思在内，寒得很。”
+"When you say 'handle,' it has a bit of a 'liquidate' connotation. It's chilling."
 
-　　钟博士倒是很潇洒：“既来之则安之么，这些都是有用的人才，可以吸收到队伍里来。”
+Dr. Zhong was quite nonchalant. "Since they are here, let them be at ease. These are all useful talents. We can absorb them into our ranks."
 
-　　“小郭好说，属于可以教育好的同志。两美国人怎么办？”
+"Little Guo is easy to deal with. He's a comrade who can be educated. What about the two Americans?"
 
-　　“一个不是华裔吗？”
+"Isn't one of them of Chinese descent?"
 
-　　“是个ABC。根本不认同你。”
+"He's an ABC. He doesn't identify with you at all."
 
-　　“这里是什么地方，他想找谁认同去，17世纪的英国人还是荷兰人？只有我们才是先进文明的代表。他不认同也得认同。”[王洛宾][y003]对此倒比较乐观。
+"What does it matter where we are? Who does he want to identify with? The 17th-century English or the Dutch? Only we represent advanced civilization. He'll have to identify with us whether he wants to or not," [Wang Luobin][y003] said, rather optimistically.
 
-　　“这倒是，纽约现在还是个农村吧？”
+"That's true. New York is still just a village right now, isn't it?"
 
-　　“二年前荷兰人才取得曼哈顿岛，这会它叫新阿姆斯特丹。”于鄂水说。
+"The Dutch only acquired Manhattan Island two years ago. Right now, it's called New Amsterdam," said Yu E'shui.
 
-　　[马千瞩][y005]说：“个人意见：可以吸收他们，这几个都是正规的执法人员，有知识、有武器使用经验，充实执法队伍很有用。老是由军事组人员代行治安任务的话他们太忙了。”
+[Ma Qianzhu][y005] said, "My personal opinion: we can absorb them. These are all regular law enforcement officers with knowledge and experience in using weapons. They would be very useful for strengthening our law enforcement team. It's too much for the military group to always be acting as a police force."
 
-　　冉耀连连点头，表明支持马委员的意见。接着他又提出了建议，那意外卷入的一家人里，儿媳也是警察出身，还是个刑警，他申请也把她调入治安小组。
+Ran Yao nodded repeatedly, showing his support for Commissioner Ma's opinion. He then made another suggestion. In the family that was accidentally caught up, the daughter-in-law was also a former police officer, a criminal investigator. He requested that she also be transferred to the Public Security Group.
 
-　　“你们说得热闹。”[萧子山][y001]说，“到现在人还以为我是一精神病呢。有人愿意为一群精神病打工么？”
+"You all talk a good game," said [Xiao Zishan][y001]. "But they still think I'm a mental patient. Is anyone willing to work for a group of mental patients?"
 
-　　“得有什么证明我们是真得……手机没信号？”[王洛宾][y003]说。
+"We need some proof that we're for real... No cell phone signal?" said [Wang Luobin][y003].
 
-　　“这世界上总有没信号的地方。”
+"There are always places in the world with no signal."
 
-　　“GPS没信号。”
+"No GPS signal."
 
-　　“被你们屏蔽了。”
+"You're jamming it."
 
-　　“烽火台。”
+"The beacon tower."
 
-　　“古迹。要不就是伪古建。”
+"An ancient monument. Or a fake one."
 
-　　“明代的家具。”
+"Ming Dynasty furniture."
 
-　　“现代也能做。”
+"Can be made in modern times."
 
-　　[王洛宾][y003]眨巴了下眼睛，想不出还有什么新玩意了。
+[Wang Luobin][y003] blinked, unable to think of anything else new.
 
-　　“这些我都说过了，没用啊没用。”[萧子山][y001]无奈的摊开了手。
+"I've said all this. It's useless, useless," [Xiao Zishan][y001] said, spreading his hands helplessly.
 
-　　于鄂水却说：“把他们都放了吧。”
+But Yu E'shui said, "Let them all go."
 
-　　“放了？！”所有人的目光都注视到了他身上。
+"Let them go?!" All eyes turned to him.
 
-　　“对，放了。让他们自己去看。”于鄂说说，“他们不是不相信这里是1628年的海南么。耳听为虚，眼见为实。当年[文总][y002]的虫洞大伙也是亲眼看到了才信的。事情太超出常理了，换我我也不信。让他们自己去走走看看，用事实说话。”
+"Yes, let them go. Let them see for themselves," Yu E'shui said. "They don't believe this is Hainan in 1628, do they? Hearing is deceptive, seeing is believing. Back then, we all had to see [Director Wen][y002]'s wormhole with our own eyes to believe it. This situation is too far beyond common sense. If it were me, I wouldn't believe it either. Let them go and see for themselves. Let the facts speak for themselves."
 
-　　“万一他们逃走，路上出了事怎么办？老老少少的又没有注射疫苗。”
+"What if they run away and something happens to them on the road? They're old and young, and they haven't been vaccinated."
 
-　　“那也没办法。革命是要付出代价的。不愿意做同路人，生死就只能随意了……”于鄂水的小眼睛闪闪发亮，看得大伙菊花一紧。
+"There's nothing we can do about that. Revolution requires sacrifice. If they are unwilling to be our fellow travelers, their life and death can only be left to fate..." Yu E'shui's small eyes gleamed, making everyone clench their buttocks.
 
-　　“可以把这七个人一起放掉。”邬德嘿嘿地笑了下，“这会肯定会抱团走，等走了一段时间之后，发觉不对就会闹起来……”
+"We can release all seven of them together," Wu De said with a chuckle. "They will definitely stick together for now. After walking for a while and realizing something is wrong, they'll start to fall apart..."
 
-　　钟利时提出了反对意见：“根据审问纪录，这七个人的背景、能力都很不错，要放穿越小说里当猪脚都没问题。合在一起，难保海南不出现第二股穿越势力！就算没有我们这样的科技基础，也可能投靠大明啊！”
+Zhong Lishi raised an objection. "According to the interrogation records, the backgrounds and abilities of these seven people are all quite good. In a transmigration novel, any of them could be the protagonist. If they stick together, there's no guarantee a second transmigrator force won't appear in Hainan! Even without our technological foundation, they could still defect to the Ming!"
 
-　　邬德笑了一下：“没可能。先不说大明会不会收留他们，你就看这七人团体多复杂，又有老百姓，又有人民警察，又有美国特务的——还有四个女的。我们都是为了一个目标走到一起的，还经历了一年多的磨合期。他们有什么共同目标去奋斗？遇到一点挫折，不马上闹翻才怪。”
+Wu De smiled. "Impossible. Let's not even talk about whether the Ming would take them in. Just look at how complex this group of seven is. You have ordinary people, a People's Police officer, and American agents—and four women. We all came together for a common goal and went through a break-in period of over a year. What common goal do they have to strive for? At the first sign of a setback, it would be a miracle if they didn't immediately fall out."
 
-　　“等闹完了自然就明白了，也就回来了。”邬德慢悠悠的说，“到那时候再收留他们，比现在[子山][y001]这样苦口婆心还挨骂好多了。”
+"After they've had their fill of arguing, they will naturally understand and come back," Wu De said slowly. "Taking them in then would be much better than [Zishan][y001] trying to persuade them now and getting cursed for it."
 
-　　“万一给明朝人抓了，或者干脆杀了呢，不是没可能的。”
+"What if they get captured by the Ming, or even killed? It's not impossible."
 
-　　“这么奇装异服的特殊人物，为什么要杀？明朝人又不是野人，肯定会留着，让他们吃几天苦头再救出来不是更好。”邬德说，“真要运气不好挂了，也没办法。”
+"Why would they kill such strange and special people? The Ming officials are not savages. They will definitely keep them. Isn't it better to let them suffer a bit before we rescue them?" Wu De said. "If they are really unlucky and die, there's nothing we can do."
 
-　　[萧子山][y001]点点头：“这样也好，我建议把他们的东西检查一下，把那些需要的都留下，就发一些最基本的口粮和工具什么的……”
+[Xiao Zishan][y001] nodded. "That's a good idea. I suggest we check their belongings, keep what we need, and just issue them some basic rations and tools..."
 
-　　“不，”邬德打断了他，“既然要放人，干脆大方点，全都还给他们，充分体现我们来去自由的政策。即使都损失了也没所谓，这些东西本来就是多出来的，不用心疼。”
+"No," Wu De interrupted him. "Since we are letting them go, let's be generous. Give them back everything. Fully embody our policy of freedom to come and go. Even if everything is lost, it doesn't matter. These things were extra anyway, no need to feel bad about it."
 
-　　“要是明朝的地方官抓到他们，会不会把我们的底漏出去呢？”
+"If the local Ming officials capture them, will they leak our secrets?"
 
-　　“那又如何？”邬德反问道，“他们当我们是精神病，大明的官吏也一样拿他们当疯子。再说语言能不能通都难说。”
+"So what?" Wu De retorted. "They think we are mental patients, and the Ming officials will also treat them as lunatics. Besides, it's hard to say if they can even communicate."
 
-　　郭逸没有遭遇想像中的拷打逼供，还得到了几个馒头和一点榨菜。吃完了他就被送到一间舱房里。桌子上摆着一个不锈钢锅子和几个半空的盘子，薛子良正狼吞虎咽地啃着馒头，稀饭喝得刺溜刺溜的。这个100kg的彪形大汉的吃相可够难看的，萨琳娜花容憔悴，一天没吃饭眼窝都深了下去，一双蓝眼睛变得无精打采，手里捏着吃了半个的馒头，看样子吃不大下去。
+***
 
-　　看来即使是ABC，也还有一个中国胃，纯种洋马就明显水土不服了。
+Guo Yi did not encounter the torture and interrogation he had imagined. He was even given a few steamed buns and some pickled vegetables. After eating, he was taken to a cabin. On the table was a stainless steel pot and a few half-empty plates. Xue Ziliang was ravenously devouring a steamed bun, slurping his congee loudly. The 100kg giant's table manners were quite unsightly. Sarlina looked haggard. Having not eaten for a day, her eye sockets had sunken, and her blue eyes were listless. She held a half-eaten steamed bun in her hand, apparently unable to eat much.
 
-　　“郭，他们问你什么了？”薛子良吞下最后一口馒头，顺手拿手背擦了下嘴。
+It seemed that even an ABC still had a Chinese stomach. The pure-bred Westerner was clearly not acclimatized.
 
-　　“问了，我没说。”
+"Guo, what did they ask you?" Xue Ziliang asked after swallowing his last mouthful of steamed bun, wiping his mouth with the back of his hand.
 
-　　“对不起，郭，我们什么都说了……”薛子良一脸无辜的说。
+"They asked. I didn't say anything."
 
-　　“知道，知道，你们那被俘政策，很人性化，很人性化……”郭逸对这个问题已经不感兴趣了，他关心的是这些匪徒会如何处置他们。
+"Sorry, Guo, we told them everything..." Xue Ziliang said with an innocent look.
 
-　　不再审问他，可能是因为满足于薛子良他们的口供，也可能是觉得他们已经没用了……郭逸的寒毛都倒竖起来。看着吃得心满意足的薛子良，他还真是无忧无虑啊。
+"I know, I know. Your policy on capture is very humane, very humane..." Guo Yi was no longer interested in this issue. He was concerned about how these bandits would dispose of them.
 
-　　“郭，你是不是在害怕。”薛子良凑过来问。
+They weren't interrogating him anymore, perhaps because they were satisfied with Xue Ziliang's confession, or perhaps because they thought they were no longer useful... The hairs on Guo Yi's neck stood on end. Looking at the contentedly eating Xue Ziliang, he was really carefree.
 
-　　郭逸很想保持住中国人民的英勇气概，但一说还是露了底：“有点……这群人你觉得怎么样？”
+"Guo, are you scared?" Xue Ziliang leaned over and asked.
 
-　　薛子良从内衣口袋里摸出一支烟，打火机被收走了，他只能凑在鼻子下边闻边说：“我觉得他们没恶意。”
+Guo Yi wanted to maintain the heroic spirit of the Chinese people, but as soon as he spoke, the truth came out. "A little... What do you think of this group of people?"
 
-　　“？”
+Xue Ziliang took a cigarette from his inner pocket. His lighter had been confiscated. He could only hold it under his nose and sniff it as he spoke. "I don't think they have any malicious intent."
 
-　　“有件很奇怪的事情，”薛子良收起他那笑嘻嘻的神情，“刚才审问我们的那个人，一直想让我们相信……”他压低了声音，“现在是1628年。”
+"?"
 
-　　“什么？！”郭逸不相信自己的耳朵了——这么荒谬的话也说的出来？
+"There's something very strange," Xue Ziliang said, his playful expression gone. "The person who interrogated us just now kept trying to make us believe..." he lowered his voice, "that it's the year 1628 right now."
 
-　　“很古怪吧。一开始我觉得他疯了。但是萨琳娜说，他没疯，绝对精神正常。”为了加强说服力，“萨琳娜有心理学硕士学位，一个人是不是疯了，她是看得出来的。”
+"What?!" Guo Yi couldn't believe his ears. How could they say something so absurd?
 
-　　“那也未必，比如传销……”郭逸发觉这个例子不大好，美国人很难理解中国特色的传销业务，“比如邪教组织吧，要从精神病学科上说他们也没疯……”
+"It's very strange, right? At first, I thought he was crazy. But Sarlina said he's not crazy, he's definitely mentally sound." To add to his persuasiveness, he said, "Sarlina has a master's degree in psychology. She can tell if a person is crazy or not."
 
-　　薛子良点点头：“没错。我觉得这个组织有那么点邪教的味道。”
+"That's not necessarily true. For example, pyramid schemes..." Guo Yi realized this was not a good example; it was difficult for an American to understand the Chinese-style pyramid scheme business. "For example, cult organizations. From a psychiatric perspective, they are not crazy either..."
 
-　　邪教这方面不是小郭的业务的范畴，不过同处一个机构，这点基本常识还是有的。
+Xue Ziliang nodded. "That's right. I think this organization has a bit of a cult flavor to it."
 
-　　“可他们没有邪教的特征……比如教主，还有图腾象征物之类的东西。”
+Cults were not within Little Guo's area of expertise, but being in the same agency, he still had some basic knowledge.
 
-　　“你知道有个地下组织，叫生存教会吗？”
+"But they don't have the characteristics of a cult... for example, a cult leader, or totems and symbols."
 
-　　“生存教会？”
+"Have you heard of an underground organization called the Church of Survival?"
 
-　　“对，这是个起源不详的地下组织。以大量储备物资，构筑工事以求能渡过核战争或者其他足以摧毁正常社会秩序的大灾难……对了，他们的教主貌似叫文斯特。一直鼓吹末日来临论，鼓吹生存狂们要做好准备。”
+"The Church of Survival?"
 
-　　“宣扬世界末日也是邪教的特征。”小郭想了起来。
+"Yes, it's an underground organization with an unknown origin. They stockpile large amounts of supplies and build fortifications in order to survive a nuclear war or other major disasters that could destroy the normal social order... By the way, their leader seems to be called Wen-ster. He has been constantly preaching about the coming of doomsday, advocating for survivalists to be prepared."
 
-　　“还记得我们看的货物清单么？那些东西，作为贸易来说太多太复杂，但是作为重建文明的需要呢？”
+"Preaching about the end of the world is also a characteristic of a cult," Little Guo remembered.
 
-　　“你是说？！”
+"And remember the cargo list we saw? Those things, as trade goods, are too many and too complex. But what if they are for rebuilding civilization?"
 
-　　“嗯，我怀疑这里有一个巨大的骗局。”薛子良一字一句道，“有人虚构了一个新世界。”
-[y001]: /characters/y001 "萧子山"
+"Are you saying?!"
+
+"Yes, I suspect there is a huge scam here," Xue Ziliang said, word by word. "Someone has fabricated a new world."
+[y001]: /characters/y001 "Xiao Zishan"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
 [y005]: /characters/y005 "马千瞩"
