--- a/_posts/2009-10-29-2-01200.md
+++ b/_posts/2009-10-29-2-01200.md
@@ -1,89 +1,93 @@
 ---
 layout: post
-title: 第十二节 临高城
+title: "Section 12: Lingao Town"
 category: 2
 path: 2009-10-29-2-01200.md
 tag: [normal]
 ---
 
-　　郭逸一听来了精神，怪不得领导们经常出国，这外国和尚念的洋经的确不一样。赶紧扯着薛子良要他说说这里的细节问题。
+Guo Yi's spirits lifted. No wonder the leaders often went abroad; the scriptures chanted by foreign monks were indeed different. He quickly pulled Xue Ziliang aside to ask for more details.
 
-　　薛子良问：“你知道世界共和国案吗？”
+Xue Ziliang asked, "Have you heard of the World Republic case?"
 
-　　“不大清楚。”
+"Not really."
 
-　　“这是个很典型的案件，我觉得非常符合眼下的局面。”这是个发生在1960年的古怪案子，一个自称是阿道夫.希特勒私生子的名叫弗兹.伯特的人创立的所谓世界共和国。此人在欧洲的媒体上宣称：1960年12月16日属于金星的第三飞碟舰队要在柏林坦波劳夫机场着陆。阿兹，宇宙别动队的总司令将立即宣布地球人弗兹·伯特为世界共和国最高政府总统。弗兹总统将立即要求地球上所有国家的军队投降，毁掉所有军队的弹药库，所有的军人将禁止出营房。
+"It's a very typical case, and I think it fits the current situation very well." It was a strange case that occurred in 1960. A man named Frotz-Boot, who claimed to be the illegitimate son of Adolf Hitler, founded the so-called World Republic. This person announced in the European media that on December 16, 1960, the third flying saucer fleet from Venus would land at Berlin's Tempelhof Airport. Atz, the commander-in-chief of the cosmic mobile team, would immediately declare the earthling Frotz-Boot as the president of the supreme government of the World Republic. President Frotz would then immediately demand the surrender of all armies on Earth, destroy all military arsenals, and forbid all soldiers from leaving their barracks.
 
-　　这个案子和形形色色的诈骗案没什么区别，唯一的区别是，这个弗兹.伯特并没有任何诈骗行为，他真心相信自己是金星人选择的世界共和国总统，所以后来此人并没有被追究任何刑事责任。
+This case was no different from various other scams, with the only distinction being that this Frotz-Boot did not commit any fraudulent acts. He genuinely believed he was the president of the World Republic chosen by the Venusians, so he was not held criminally responsible later.
 
-　　“这个和我们面对的局面是不是很象？我相信他们从上到下都觉得到了一个新世界，实际上很可能这里只是越南海域里的一个荒岛。说不定是组织里某个别有用心的人特意租下来的。”
+"Isn't this very similar to the situation we are facing? I believe they all, from top to bottom, think they have arrived in a new world. In reality, this is likely just a deserted island in the waters of Vietnam, perhaps specially rented by someone in the organization with ulterior motives."
 
-　　“这不就是一个外国版的当皇帝么……”小郭打了个哈欠，心想这算什么，1949年以来我国的穷乡僻壤里自称真命天子少说也有十来个了。他闲来没事的时候就调过这些材料看——多数案子非常有娱乐性。
+"Isn't this just a foreign version of playing emperor..." Little Guo yawned, thinking this was nothing. Since 1949, there had been at least a dozen self-proclaimed 'True Sons of Heaven' in the remote corners of our country. He had read through these case files in his spare time—most of them were very entertaining.
 
-　　解释的倒是不错，但还是无法说明一切信号都消失的问题。正胡思乱想间，舱门打开了，有人丢了三条毯子进来。
+The explanation was not bad, but it still couldn't account for the disappearance of all signals. As his mind wandered, the cabin door opened, and someone threw in three blankets.
 
-　　“好好休息，明天上路。”来人简单的通知。
+"Get a good rest. You're hitting the road tomorrow," the person announced simply.
 
-　　“看来明天会把我们换地方，我得好好休息，明天有力气走路。”薛子良吃饱喝足，又扯了一会淡，已经困了，裹上毯子睡觉了。萨琳娜一直没说话，此时也睡觉了。
+"Looks like they're moving us to another place tomorrow. I need to get a good rest to have the strength to walk tomorrow." Xue Ziliang, having eaten and drunk his fill and chatted for a while, was already sleepy. He wrapped himself in a blanket and went to sleep. Sarlina had been silent all this time and also went to sleep.
 
-　　作为一个真正的中国人，小郭对汉语的博大精深是深有体会的。“上路”对身处深陷这样环境的人来说真是个不吉利的词。
+As a true Chinese, Little Guo had a deep appreciation for the vastness and profundity of the Chinese language. For someone in such a predicament, the phrase "shàng lù" (to get on the road) was a truly inauspicious term.
 
-　　丢毯子进来的孟贤显然没意识到自己无意的一句话，让小郭失眠了半宿，还在小笔记本上涂了写，写了涂几页遗书。
+Meng Xian, who had thrown in the blankets, was obviously unaware that his casual remark had caused Little Guo to lose half a night's sleep, during which he scribbled and rewrote several pages of a last will and testament in his small notebook.
 
-　　入夜，临高县城一片死寂。
+***
 
-　　起更之后城里已经静街宵禁，黑黝黝的城池显得特别的阴森。贯通全城石板路的道口都站着兵丁，预备着盘查行人——今天从四乡和城外已经涌入了不少人，拖家带口的，有的还带着猪牛鸡鸭和猫狗，县里已经把路旁的各所庙观都打开收容这些避难的农民，还是有许多人露宿在石板道两侧。即使是畜生，大约也知道灾祸临头，很少有叫唤的。只有不懂事的小孩还在哭闹，被大人小声的呵斥。
+At night, Lingao county town was deathly still.
 
-　　衙署和庙观门外都挂着红色的或白色的纸灯笼，灯光昏暗，在房檐下摇摇摆摆。在微弱的灯光下，可以看见墙壁上贴着布告。不时有更夫提着小灯笼，敲着梆子，和着几个民壮走过。
+After the first watch, a curfew had been imposed in the town, and the dark city walls looked particularly gloomy. Soldiers stood at the intersections of the stone-paved roads that ran through the town, ready to question pedestrians. Many people had already poured in from the surrounding countryside and outside the town today, dragging their families along, some even with pigs, cattle, chickens, ducks, cats, and dogs. The county had opened up all the temples along the roads to accommodate these refugee farmers, but many were still sleeping on the sides of the stone roads. Even the animals, perhaps sensing that disaster was imminent, rarely made a sound. Only the ignorant children were still crying, being hushed by the adults.
 
-　　城头上非常安静，每隔不远有一盏灯笼，民壮们在城墙上来回巡视。自从一早博铺烽火台告警，然后符巡检又仓皇的逃回来，这城里的气氛就变得异常的紧张了。街道的黑影里不时有人在窃窃私语。
+Red or white paper lanterns hung outside the government offices and temples, their light dim, swaying under the eaves. In the faint light, notices could be seen pasted on the walls. From time to time, a night watchman would pass by, carrying a small lantern and beating a wooden clapper, accompanied by a few militiamen.
 
-　　“海贼该不会已经退了吧？”有人在在屋檐下小声的说话。
+The top of the city wall was very quiet. Lanterns were hung at regular intervals, and militiamen patrolled back and forth. Since the Bopu beacon tower had raised the alarm in the morning, and then Inspector Fu had fled back in panic, the atmosphere in the town had become extremely tense. People whispered in the dark shadows of the streets.
 
-　　“各村都还没消息来，难说。”
+"Do you think the pirates have retreated?" someone whispered under the eaves.
 
-　　“这起海贼，过往都是捞一票就走。说不定这会船都走了。”
+"There's no news from the villages yet. It's hard to say."
 
-　　“要真走了，吴太爷还会叫人去求救么。”有人神秘兮兮的说，“今天下午，主簿吴老爷去后所（后所，即海南的内附卫五千户属下的后所屯，在临高县，有屯所二处）讨救兵了。”
+"These pirates usually just grab what they can and leave. Maybe their ships are already gone."
 
-　　“海贼势这么大？”一个黑瘦的汉子惴惴不安，这是个射耕人【注：射耕人，本福建人。射地而耕也，子孙尽闽音】，在临高开荒种地好不容易才积攒下一点家业，去年在家乡刚讨了老婆带来。这会他老婆正紧紧地抱着一只猪娃子，身边两个大竹笼里，鸡鸭臭屎味道熏人，她却毫不在意。
+"If they were really gone, would Magistrate Wu still be sending people for help?" someone said mysteriously. "This afternoon, Master of Records Wu went to the Rear Post (Housuo, a military colony under the Hainan Guard, located in Lingao County) to ask for reinforcements."
 
-　　“不是大，是很大。”一个小商贩模样的人大约见过些市面，绘声绘色地说着，“这几年两广的洋面上就没太平过，什么扬二了，刘香了，官军都奈何不了他们，俞大帅剿了不知道多少次，败多胜少，听说朝廷正商量着要招安呢。”
+"Are the pirates that powerful?" a dark, thin man asked uneasily. He was a "shooting cultivator" [Note: Settlers from Fujian. They "shot" for land to cultivate, and their descendants all spoke with a Fujianese accent]. He had worked hard to build a small fortune by reclaiming land in Lingao and had just brought his new wife from his hometown last year. At this moment, his wife was tightly clutching a piglet, and beside her were two large bamboo cages, reeking of chicken and duck droppings, which she paid no mind to.
 
-　　“招安了就太平了吧。”有人说。
+"Not just powerful, very powerful," a small merchant-like person, who had probably seen a bit of the world, said vividly. "The seas off Guangdong and Guangxi haven't been peaceful these past few years. There's Yang Er, Liu Xiang... the government forces can't do anything about them. Marshal Yu has suppressed them countless times, with more defeats than victories. I hear the court is discussing offering them amnesty."
 
-　　“太平，我看未必。”小商贩愤愤道，“那扬二招安过一次，结果还是祸害老百姓，这二年每次过海我都悬着心，蚕村都的符三就是过海的时候被杀的，连个尸首都没了……”
+"If they get amnesty, things will be peaceful, right?" someone said.
 
-　　“这起子海贼，不会攻打县城吧？”
+"Peaceful? I doubt it," the small merchant said resentfully. "That Yang Er was granted amnesty once, but he still ended up harming the common people. Every time I've crossed the sea these past two years, my heart has been in my throat. Fu San from Can Village was killed while crossing the sea, not even a body was found..."
 
-　　“围攻县城还是三十年前提南村闹黎变的时候了，我爷爷还给征了当了民壮守城。那群黎人，都和疯了一样，人山人海的攻城，后来马矢又来一次，虽然没攻城，可城门也没敢开。”【注：提南村黎民暴动是在万历二十五年，定安黎人马矢暴动是在万历二十七年】
+"These pirates, they won't attack the county town, will they?"
 
-　　“这次应该也能平安无事的过去吧。”
+"The last time the county town was besieged was thirty years ago during the Li rebellion in Tinan Village. My grandfather was even conscripted as a militiaman to defend the city. Those Li people were like madmen, attacking the city in human waves. Then Ma Shi came again, and although they didn't attack the city, the gates didn't dare to open." [Note: The Tinan Village Li people's uprising was in the 25th year of the Wanli reign, and the Ma Shi Li people's uprising in Ding'an was in the 27th year of the Wanli reign.]
 
-　　正说着话，典史老爷带着几个人正从街上走过，见这群人说得热闹，不由得大声呵斥：“蛮子们都胡说什么，再胡诌看本官不治你个扰乱人心之罪！”
+"This time should also pass peacefully, right?"
 
-　　【注：明代海南的城里人叫农村人蛮子，农村人则呼城里人为赤父。当然都是骂人的话。】
+As they were talking, the Master of Law, leading a few men, passed by on the street. Seeing the group talking animatedly, he couldn't help but shout, "What nonsense are you barbarians talking about? If you keep spouting nonsense, I'll have you punished for disturbing the peace!"
 
-　　老爷一发威，众人都不敢吭声。从今天一早戒严开始，因为多说几句话，或者多看了几眼就被拉去打板子、枷号示众的倒霉蛋有十来个了。
+[Note: In the Ming Dynasty, people in Hainan's towns called rural people 'barbarians', while rural people called townspeople 'red fathers'. Both were, of course, insults.]
 
-　　看得典史老爷带人去远了，那小商贩才咕哝道：“就知道对小老百姓发威，有本事去打海贼……”
+With the official's display of authority, no one dared to make a sound. Since the martial law began this morning, a dozen unlucky souls had been beaten with the cane or put in the cangue for public display just for saying a few extra words or looking around too much.
 
-　　“你少说几句罢！”一个老者制止了他，“这是什么时候？嚼这没用的舌头。”
+Only after the Master of Law and his men were far away did the small merchant grumble, "He only knows how to flex his muscles on us common folk. If he's so capable, he should go fight the pirates..."
 
-　　今天晚上，临高县令正坐在花厅里，他名叫吴明晋，南直隶人，年近五十的模样，头发已经花白，他本是举人，奈何科场蹉跎，四十多了也没登科。大挑到一个县令，还是到这南垂边鄙的地方。临高虽然置县久远，即使从县治迁徙到莫村算，也都有五百年了。但在他这个南直人看来还是荒芜的不毛之地。上任以来他也想勉力为老百姓做点事情，修水利、开荒地，劝课农桑……能留个贤名。但是这些年天灾人祸不断，沿海的烽火台一月数警，不是博铺就是石牌、马袅，海贼处处来袭，官军束手无策，县里只好关门闭守，用“贼饱自去”的策略应对。去年秋后又是台风，村落民宅被毁无数，人民流离失所，他叫人设粥场、收敛无主尸，结果还是出了时疫，死了许多人。
+"You should say a few words less!" an old man stopped him. "What time is it now? Stop wagging that useless tongue."
 
-　　【注：查临高县志，天启－崇祯年间有记载的县令共五人，其中叶耀和吴明进是天启末－崇祯初在任，因为上下任时间都不可考，就用了后一位。】
+***
 
-　　原本这次烽火台告警，他也没太当回事，海盗袭扰对这里已经是家常便饭了。但是符柏文带着弓兵逃回来说得一席话，着实把他惊吓不轻。
+Tonight, the Magistrate of Lingao County was sitting in his flower hall. His name was Wu Mingjin, a native of Southern Zhili. He looked to be nearly fifty, his hair already graying. He was a provincial graduate, but had been unlucky in the imperial examinations and had not passed even in his forties. He was selected for a county magistrate position, and a remote one at that. Although Lingao had been a county for a long time, even counting from when the county seat was moved to Mocun, it had been five hundred years. But in the eyes of this man from the south, it was still a barren and desolate land. Since taking office, he had tried to do some things for the common people: building water conservancy projects, reclaiming wasteland, promoting agriculture... hoping to leave a good name. But these years had been filled with natural and man-made disasters. The coastal beacon towers raised the alarm several times a month, whether it was Bopu, Shipai, or Ma'niao. Pirates attacked everywhere, and the government forces were helpless. The county could only close its gates and adopt the strategy of "letting the thieves leave after they've had their fill." Last autumn, there was another typhoon that destroyed countless villages and houses, displacing the people. He had set up soup kitchens and collected unclaimed bodies, but an epidemic still broke out, and many people died.
 
-　　来得海贼所乘的是前所未见的“巨舶”，船身比临高文庙的大成殿还高，跟随的那些船只，每艘都比官军的战舰大，都不用帆桨，在海面上来去自如，犹如神技。
+[Note: According to the Lingao County Annals, there were five recorded magistrates during the Tianqi-Chongzhen era. Among them, Ye Yao and Wu Mingjin were in office during the late Tianqi-early Chongzhen period. Since the exact dates of their terms are unknown, the latter was used.]
 
-　　最不可思议的是那些船居然是铁的！铁做得巨船能浮在水上，这大大的超越了他的理解范围。人对超出其理解范围的东西有着本能的恐惧。
+Originally, he hadn't paid much attention to this beacon alarm. Pirate harassment was already a common occurrence here. But the words of Fu Baiwen, who had fled back with his archers, had truly frightened him.
 
-　　等到再看到这些人真得开始登岸的时候，符柏文赶紧带人一路狂奔的撤回县城——他本能的预感到，这些人和他以往看到过听说过的任何海贼或者商人都不是一回事，他们不可能是为了抢劫老百姓的几担咸鱼几石大米才来临高的！
+The pirates had arrived on an unprecedented "giant ship," its hull taller than the Great Accomplishment Hall of the Lingao Confucian Temple. The accompanying ships were each larger than the government's warships, and they moved freely on the sea without sails or oars, as if by magic.
 
-　　吴明晋当然不能只听他的一面之词——武人畏战，夸大其词是常有的事情。慌乱之余他还是派出了县衙里一个熟悉博铺附近状况的疍家出身的皂隶去探视。中午回来的时候，那皂隶连话都说不利索了。吴太爷从他那七颠八倒的描述中知道，这伙海贼人数很多，有上千。上了岸之后有车可以在海滩上行走，车上即不套马，也不驾牛，人坐在上面就会走。有的车能够轻轻松松的搬起很大很大的铁箱子运来运去……还有许多他说不清的东西……一言蔽之，这伙人邪气十足。
+The most incredible thing was that the ships were actually made of iron! An iron giant ship that could float on water was far beyond his comprehension. People have an instinctive fear of things that are beyond their understanding.
 
-　　这下他才急了。他倒不怎么相信邪术之类的说法。吴明晋到海南当官，路上在广东看到过葡萄牙人的大船和火炮，还见识了望远镜，知道海外之人多有奇巧之物，焉知这群海贼会不会仗着某些海外奇异之物来攻打县城？临高城里除了皂隶衙役，可用的不过是八十民壮外加巡检司回来的十二个弓兵，满打满算也才一百多人。
+By the time he saw these people actually begin to land, Fu Baiwen had quickly led his men on a mad dash back to the county town. He instinctively felt that these people were different from any pirate or merchant he had ever seen or heard of. They couldn't have come to Lingao just to rob the common people of a few loads of salted fish and a few shi of rice!
 
-　　于是他赶紧叫县丞吴亚带着银子去后所搬救兵。这会吴亚回来禀报：后所的千户应了，明天一早便派三十人一门炮过来，只是事后得给每人一石米的赏钱。
+Of course, Wu Mingjin couldn't just take his word for it—it was common for military men to exaggerate out of fear of battle. In his panic, he still sent a bailiff of Dan origin from the county yamen, who was familiar with the Bopu area, to investigate. When the bailiff returned at noon, he could barely speak coherently. From his jumbled description, Magistrate Wu understood that there were many pirates, over a thousand of them. After landing, they had vehicles that could move on the beach, without horses or oxen, that moved just by having people sit in them. Some vehicles could easily lift very large iron boxes and move them around... and many other things he couldn't describe... In short, this group of people was full of evil magic.
+
+Only then did he become anxious. He didn't really believe in things like evil magic. When Wu Mingjin came to Hainan to be an official, he had seen the large ships and cannons of the Portuguese in Guangdong on the way, and had also seen a telescope. He knew that people from overseas often had strange and ingenious things. How could he know if this group of pirates wouldn't rely on some strange overseas object to attack the county town? In Lingao town, besides the bailiffs and yamen runners, there were only eighty militiamen and the twelve archers who had returned from the inspection office, a total of just over a hundred men.
+
+So he quickly sent the County Adjutant, Wu Ya, with silver to the Rear Post to ask for reinforcements. Wu Ya had now returned to report: the Commander of a Thousand at the Rear Post had agreed. He would send thirty men and one cannon over tomorrow morning, but he demanded a reward of one shi of rice per man afterward.
