--- a/_posts/2009-10-30-2-01300.md
+++ b/_posts/2009-10-30-2-01300.md
@@ -1,105 +1,102 @@
 ---
 layout: post
-title: 第十三节 临高人的对策
+title: "Section 13: The Countermeasures of the Lingao People"
 category: 2
 path: 2009-10-30-2-01300.md
 tag: [normal]
 ---
 
-　　“赏钱好说。”吴县令一脸苦笑，比起送去的五十两银子，这三十石米还真算不了什么，“赞府辛苦了。”
+"The reward money is no problem," Magistrate Wu said with a bitter smile. Compared to the fifty taels of silver he had sent, thirty shi of rice was nothing. "You have worked hard, Adjutant."
 
-　　“事关阖城安危，安敢言辛苦。只是那李千户拿捏的很，卑职说尽了好话，才肯拨三十人。那些炮药铅子，不用也就罢了，若用了还得双倍还他。”吴亚年近四十，是个胖子，保养的很好，看起来比县令年轻多了。他是杂佐出身，没科甲正途的人那么有想法，日子倒过得逍遥自在。
+"It concerns the safety of the entire city, how dare I speak of hardship. It's just that Commander Li was very difficult. Your humble subordinate had to plead with him before he was willing to dispatch thirty men. As for the gunpowder and lead shot, it's fine if we don't use them, but if we do, we have to pay him back double." Wu Ya was nearly forty, a fat man who was well-maintained and looked much younger than the magistrate. He had come up through the ranks of miscellaneous officials and didn't have the same ambitions as those who had passed the imperial examinations. He lived a rather carefree life.
 
-　　“这也怪不得他，”吴令低着头，叹气道，“卫所之事，朝廷上下尽人皆知。他那里那有可用之兵？就算有，也不过些老弱病残，逃不脱的人罢了。”
+"He can't be blamed for that," Magistrate Wu said with his head lowered, sighing. "The state of the military garrisons is known to everyone at court. What usable soldiers could he possibly have there? Even if he did, they would just be the old, weak, sick, and disabled who couldn't escape."
 
-　　“明府说的是。”吴亚点头道，正说着话，门子来禀，县里的主簿、训导都来了，典史正带人巡逻，一时来不了，教谕则去请士绅们了。明代绅权很重，地方绅士往往能干涉地方行政，所以县内每有大事，请士绅们来商议总是不错的。
+"Your Excellency is right," Wu Ya nodded. As they were speaking, a doorman came to announce that the county's Master of Records and Director of Studies had arrived. The Master of Law was leading a patrol and couldn't come for the moment, while the County Instructor had gone to invite the local gentry. In the Ming Dynasty, the power of the gentry was significant, and local gentlemen could often interfere in local administration. Therefore, whenever there was a major event in the county, it was always a good idea to invite the gentry to discuss it.
 
-　　所谓士绅，是个复杂的阶层，上起朝廷大臣，封疆大吏，下及官宦家属、豪强地主，乃及因丁忧、革职、致仕等各种缘故返回原籍的官员；身有科名而未出仕的举人进士，都可以包括在内。他们因种种关系，和省级封疆大吏及朝廷有相当密切的联系，更有手眼通天直达皇宫内廷的。州县衙门的七品八品九品官儿们，尽可在平民百姓跟前充老爷，但在这些乡绅面前就要大打折扣。
+The so-called gentry was a complex class, ranging from high court ministers and provincial governors down to the families of officials, powerful landlords, and officials who had returned to their hometowns for various reasons such as mourning, dismissal, or retirement. It also included provincial and metropolitan graduates who had not yet taken up official posts. Through various connections, they had close ties with provincial governors and the imperial court, and some even had connections that reached directly into the inner court of the palace. The seventh, eighth, and ninth-rank officials of the county yamen could act like masters in front of the common people, but their authority was greatly diminished in front of these local gentry.
 
-　　临高因为是边鄙小县，士绅拢共也没几个，有的地方偏远，海盗波及不到的也就不来了。有的自设村寨招募乡勇的，此时要坐镇守御，自然也不便来。也就是在县城里和周边几个都图的绅士，他们利益相关，自然要来。
+Because Lingao was a remote and small county, there were not many gentry in total. Some lived in remote areas that the pirates couldn't reach and so didn't come. Others had built their own fortified villages and recruited local militias, and at this time, they had to stay and defend them, so it was inconvenient for them to come. Only the gentry in the county town and a few surrounding districts, whose interests were at stake, naturally came.
 
-　　眼见人都来得差不多了，吴明晋低声问身边的师爷：“刘先生还没到吗？”
+Seeing that most of the people had arrived, Wu Mingjin asked the secretary beside him in a low voice, "Has Mr. Liu arrived yet?"
 
-　　“回老爷，冯教谕亲自去接了，一会就到。”
+"Your Excellency, Instructor Feng has gone to pick him up personally. He will be here shortly."
 
-　　他点点头，把这花厅里的士绅们都看了一遍。虽花厅里，已然坐了十多个人，有的趾高气扬，有的唯唯诺诺，也有的故作深沉，拈须不语。
+He nodded and looked over the gentry in the flower hall. There were already more than a dozen people sitting there. Some were arrogant, some were obsequious, and some were pretending to be profound, stroking their beards and saying nothing.
 
-　　“诸位父老，”吴明晋没有客套，直接把谈话转入正题，“眼下的局面：海贼势大盘踞博铺不去。巨舶快船满港，明日定会溯河而上一路纵掠，局面危矣！吴赞府今日冒死出城求援，明日可到卫所兵丁三十，然而卫所之兵，不过借以壮势，断不可倚靠！”
+"Esteemed elders," Wu Mingjin said, dispensing with pleasantries and getting straight to the point. "The current situation is this: a large force of pirates is entrenched at Bopu and shows no sign of leaving. The harbor is full of giant ships and fast boats. Tomorrow, they will surely sail up the river, plundering as they go. The situation is critical! Adjutant Wu risked his life to go out of the city for help today, and tomorrow thirty soldiers from the garrison will arrive. However, the garrison soldiers can only be used to bolster our numbers; we absolutely cannot rely on them!"
 
-　　这番话说得声色俱厉，听得人不免都骚动起来。吴亚知道这不过是常见的敲山震虎而已，把局势夸大到十二万分的危险，目的无非就是勒逼这些士绅们献粮捐银。他身为这县里的老县丞，深知如今朝廷上下财政败坏到极点。临高去年又遭了台风洪水，秋粮损失大半，但是朝廷征收的三饷却不免，县里已经很窘迫了，连民壮和弓手的粮饷都欠了好几个月。如今又要防着海贼攻城，请援兵，募民壮，都得花钱。
+His words were stern, and the listeners couldn't help but stir uneasily. Wu Ya knew this was just a common tactic of beating the grass to scare the snake. By exaggerating the danger to the extreme, the goal was none other than to compel these gentry to donate grain and silver. As the long-serving county adjutant, he was well aware that the court's finances were in a state of extreme decay. Lingao had suffered from a typhoon and flood last year, and most of the autumn harvest was lost, but the three major taxes levied by the court were not waived. The county was already in dire straits, and even the salaries for the militiamen and archers were several months in arrears. Now they had to defend against a pirate attack, request reinforcements, and recruit more militiamen, all of which cost money.
 
-　　眼看这群人都惴惴不安，吴大令才缓缓道：“本官承乏来此，守土有责。城存与存，城亡与亡。各位或世受国恩，或为本城绅衿，或为科甲正途，守城之事，责无旁贷。请各与本官同心协力，共守此城，打退海贼进攻，保全城官绅百姓平安无事。不知各位有主张？”
+Seeing that the group was uneasy, Magistrate Wu said slowly, "I have been entrusted with this post and have the responsibility to defend this land. I will live or die with this city. You are all either hereditary beneficiaries of the state's grace, or the gentry of this city, or have passed the imperial examinations. The duty of defending the city is yours as well. I ask you all to work with me, with one heart and one mind, to defend this city together, repel the pirate attack, and ensure the safety of all the officials, gentry, and common people of the city. What are your thoughts?"
 
-　　众人忙起身道：“原惟大人马首！”
+The crowd hurriedly stood up and said, "We will follow Your Excellency's lead!"
 
-　　吴明晋见气氛不错，这才将他的打算说了出来：“本县虽然是小城，围长也有六百余丈，现在城中兵丁民壮不过一百余人，要分守三门，城内又涌进了许多百姓，难保没有海贼的内应，仅靠皂隶弹压，恐怕力不从心。我欲添募民壮二百人，协力守城。”
+Seeing that the atmosphere was good, Wu Mingjin then revealed his plan. "Although this is a small town, its circumference is over 600 zhang. We currently have just over a hundred soldiers and militiamen in the city. We have to defend three gates, and many common people have flooded into the city. We cannot guarantee there are no pirate spies among them. Relying on the yamen runners alone to maintain order may not be enough. I wish to recruit two hundred more militiamen to help defend the city."
 
-　　【注：明代临高县本有四门，但是北门长期堵塞不开，这是海南明代城池的一个特点，这里即有防御海盗的说法，也有风水上的意思。】
+[Note: Lingao County in the Ming Dynasty originally had four gates, but the north gate was permanently blocked. This was a characteristic of Hainan's Ming Dynasty cities, said to be for defense against pirates, as well as for feng shui reasons.]
 
-　　一位绅士说：“明府如此忠心，实是全城官绅士民之福。可是如今海贼只在博铺，并无深入县内之举，添募民壮，是否有骇视听？”
+One gentleman said, "Your Excellency's loyalty is truly a blessing for all the officials, gentry, and people of the city. But the pirates are currently only at Bopu and have not made any move to enter the county. Recruiting more militiamen, might that not cause a panic?"
 
-　　另一个也忙说：“添募民壮守御，自是良策，然去年台风洪水之后，民生凋敝，若非危急之刻，不可出此惊扰士民之策呀！”
+Another quickly added, "Recruiting militiamen for defense is a good strategy, but after last year's typhoon and flood, the people's livelihood is in decline. Unless it is a moment of extreme crisis, we should not resort to such a measure that would disturb the gentry and the people!"
 
-　　这些滑头士绅个个都是一脸难色。纷纷诉起苦来，无非是朝廷加派繁重，去年又是遭灾，佃户们多有饿死逃亡的……
+These cunning gentry all had looks of difficulty on their faces. They began to complain one after another, about the heavy taxes imposed by the court, the disaster last year, and how many of their tenant farmers had starved to death or fled...
 
-　　也有的说琼崖参将的巡船三日必到博铺，官军一到，海贼即使不遁去，汤将军守土有责，必会起白沙水寨之兵来讨伐。
+Some also said that the patrol boats of the Qiongya Brigade Commander would surely arrive at Bopu within three days. Once the government forces arrived, even if the pirates didn't flee, General Tang had a duty to defend the land and would surely lead the troops from the Baisha naval base to attack them.
 
-　　吴明晋脸色愈来愈难看，忽听门外有人道：“城池危在旦夕，诸位还在吝惜几个钱财！”说着话，冯教谕带来两个亲随，用一张藤椅将一位中年人抬了进来。众人忙纷纷起来见礼，甚是恭敬。连吴令也趋步上前，连称：“老先生”。
+Wu Mingjin's face grew darker and darker. Suddenly, he heard a voice from outside the door. "The city is in imminent danger, and you are all still stingy with a little money!" As he spoke, Instructor Feng entered with two attendants, carrying a middle-aged man in a rattan chair. Everyone hurriedly stood up to greet him with great respect. Even Magistrate Wu hurried forward, repeatedly addressing him as "Old Sir."
 
-　　这位瘫痪多年的中年人，就是临高历史上赫赫有名的刘大霖，字孟良。万历四十七年进士，这是临高自唐代置县以来第一个进士。不过登科后他即瘫痪不起，所以没有出仕。
+This paralyzed middle-aged man was the famous Liu Dalin of Lingao history, courtesy name Mengliang. He had passed the metropolitan examination in the 47th year of the Wanli reign, the first *jinshi* from Lingao since the county was established in the Tang Dynasty. However, he became paralyzed shortly after passing the exam and thus never held an official post.
 
-　　他此时不过四十出头，正值壮年，虽然身体瘫痪不利行走，但是于地方还是颇为热心的。他家就在县城西门内，一听吴令有请，没有推脱就来了。
+He was now just over forty, in the prime of his life. Although his body was paralyzed and he could not walk, he was still very enthusiastic about local affairs. His home was just inside the west gate of the county town. As soon as he heard Magistrate Wu's invitation, he came without hesitation.
 
-　　吴明晋道：“老先生于此有何良策？”
+Wu Mingjin said, "Old Sir, what good strategy do you have for this?"
 
-　　刘大霖道：“民壮是要募的。贼此刻不动，难道明日也不动了？贼人大股出动岂能只是为占个博铺？博铺离这里才三十里路，贼人朝发午至，待到兵临城下，玉石俱焚，诸位的身家还有得救么？”
+Liu Dalin said, "The militiamen must be recruited. The pirates are not moving now, but does that mean they won't move tomorrow? How can a large pirate force mobilize just to occupy Bopu? Bopu is only thirty li from here. The pirates could arrive by noon if they set out in the morning. When the army is at our gates, and all is lost, will your family fortunes still be safe?"
 
-　　他歪了下身子，身边的家仆忙帮他挪动了一下：“如今兵备颓废，还指望汤参将的人马？！诸位没听得探子回报，海贼都乘大铁船，不用帆桨来去自如么？白沙水寨就是倾巢而来，又能如何？”
+He shifted his body, and his servant quickly helped him adjust his position. "The military is in a state of decay now, and you still count on General Tang's troops?! Haven't you all heard the scouts' reports? The pirates are all on large iron ships that move freely without sails or oars. Even if the entire Baisha naval base came, what could they do?"
 
-　　众人听得，脸色又灰了一层。有个士绅小声道：“官兵都无用，募些民壮又能如何？”
+Hearing this, the faces of the crowd turned another shade grayer. A gentleman whispered, "If even the government soldiers are useless, what can a few recruited militiamen do?"
 
-　　“自古官兵不如乡勇、民壮之事多矣！前者不过求粮饷谋生计，后者却是保卫乡梓。安能相提并论？”刘进士侃侃而谈，“现今之计，求人不如求己。”他对吴明晋拱手道，“明府，大霖以为：募乡勇守御只是一事。”说着他把自己白天苦思冥想出来的几条对策说了出来：
+"Since ancient times, there have been many cases where local militias and braves were better than government soldiers! The former are just seeking a salary to make a living, while the latter are defending their hometown. How can they be compared?" Liu Jinshi spoke eloquently. "The plan now is to rely on ourselves rather than others." He cupped his hands towards Wu Mingjin. "Your Excellency, Dalin believes that recruiting local braves for defense is only one matter." He then laid out the several countermeasures he had been contemplating all day:
 
-　　一、派人去各村、图、都，晓谕地方绅士募乡勇，筑土围，以自卫计。
+1.  Send people to the villages and districts to inform the local gentry to recruit local braves and build earthen walls for self-defense.
+2.  Implement a scorched-earth policy. For villages and market towns that are too small to defend themselves, or villages in places where the main pirate force might pass, evacuate all people, property, grain, chickens, ducks, and livestock into the county town.
+3.  Conduct a census and strictly enforce the curfew to prevent pirate spies from infiltrating the city.
+4.  Send scouts to monitor the movements of the pirates at Bopu day and night.
+5.  Send a brave warrior with dozens of local braves to the main roads outside the city. If any lone pirates are caught plundering, they should be captured or killed. If the pirates have no food for a long time, they will naturally retreat.
+6.  Recruit more militiamen. The areas outside the city cannot be abandoned either. A stockade should be erected outside each of the three city gates to aid in defense.
 
-　　二、坚壁清野，凡乡村墟市卑小无力设防的、或是海贼大股可能路过地方的乡村则将人口、财物粮米，鸡鸭牲畜尽迁入县城。
+After speaking, he added, "Dalin is willing to donate thirty shi of grain!"
 
-　　三、清查户口，严明宵禁，以免贼人探子混入城内。
+With the county's only *jinshi* making such a statement, the others had to show something as well. They began to pledge ten shi here, five taels there. In a short time, they had collected three hundred shi of grain and one hundred taels of silver. Seeing Liu Jinshi being so public-spirited, offering both plans and donations, Wu Mingjin offered countless compliments and invited him to stay in the yamen as an advisor. Liu Dalin did not refuse and took up residence in the yamen. The gentry then went off to raise the silver and grain.
 
-　　四、派探子日夜监视博铺海贼的动向。
+Wu Ya organized the male refugees who had entered the city, from sixteen to sixty years old, into groups of ten, assigning them to the four gates to repair the city walls and transport bricks, stones, and rolling logs. The students of the county school were responsible for defending sections of the city wall. The students were all young and strong, their youthful fire not yet faded, their minds full of loyalty to the emperor and patriotism, and the ambition to defend their hometown. At this critical moment, each of them wore old armor taken from the county armory, topped with rusty iron helmets, and carried rusty sabers and swords, shouting orders on the wall, each looking majestic. It was just that the weapons taken from the county armory were all rotten and unusable, and blacksmiths and carpenters were temporarily called in to rush repairs.
 
-　　五、派一敢战之士，带数十乡勇在城外要道，有贼人抄掠落单的，尽可擒杀。贼人日久无粮，自然退去。
+On each of the four city gates, there were originally two "Tiger Squat" cannons, all made during the Zhengde era. Fortunately, they had all been fired during the Wanli era, which meant the cannons could still make a sound. Even a civil official like Wu Mingjin knew that these things were just for show and couldn't be relied upon.
 
-　　六、多募民壮，城外也不可弃守，三城门外宜各立一寨，以利守御。
+The officials discussed that with so many refugees in the city, a slight misstep could trigger a popular uprising. So they ordered the Master of Records and the county school's Instructor and Director of Studies to set up soup kitchens in front of the Confucian temple and to boil herbal tea for drinking. The Master of Law led the yamen runners to patrol the streets and suppress the populace. Originally, Magistrate Wu had wanted to execute someone to establish his authority, but he was dissuaded by Liu Jinshi, who said that it was not appropriate to kill at this time, lest it fail to establish authority and instead provoke a popular uprising. However, the beatings with the cane became more frequent, and the sound of bamboo hitting flesh and the miserable cries and pleas of the unlucky ones could be heard all over the street. The common people stood silently in the cold autumn night wind.
 
-　　说罢，他又道：“大霖愿献粮三十石！”
+***
 
-　　本县的唯一进士如此表态，其他人也不得不所有表示，于是便纷纷这个十石，那个五两的。一会功夫，募集了三百石粮食和一百两银子。吴明晋见刘进士如此急公好义，出谋献策又捐粮的，忙说了无数的恭维话，并请他留在衙中参谋，刘大霖也不推辞，就在衙内住下。这边又绅士们自去筹集银米不提。
+At this time, in a narrow alley behind the county yamen in the northern part of the city, a faint light shone from a residence. The courtyard was silent. A lantern was placed on the wellhead, and next to the lantern were several iron chests. A man and a woman sat on the bluestone slab of the well platform, staring blankly at a tall kapok tree by the well, not saying a word for a long time. The autumn night was already chilling, and both were wrapped in felt blankets.
 
-　　吴亚把进城的乡民里的男丁从十六到六十的都编排起来，每十人一甲，分派四门，修补城墙，运送砖石檑木。县学的生员们，负责城墙上分段守御，生员们都是年轻力壮之人，少年火性未褪，还是一脑门子的忠君爱国，保卫乡梓的雄心壮志，此刻形势危急，个个身上穿着县武库里取出的陈年披甲，顶生了绣的铁盔，拎着生锈的刀剑在城上呼吆喝令，个个威风凛凛。只是县武库里取出的刀剑枪矛都朽烂不堪了，临时叫铁匠木匠赶工修补。
+The man used a rope and grapple to lower the chests one by one into the well. When a chest entered the water, he would shake the rope to release the grapple. With a gurgle from the well, it would disappear from sight.
 
-　　城内四门上原各有虎尊炮二门，都是正德年间造的，幸好万历年间都打过说明炮还能响。就算吴明晋这样的文官也知道这玩意也就是壮个胆，指望不了的。
+The woman stood up from the side, shook out her long skirt, and finally spoke. "Is it safe here? My heart trembles when I think of it—this is the savings of several generations of our family..."
 
-　　官吏们商议，此时城里避难民众众多，稍有不慎就会引发民变。便命主簿和县学的教谕、训导在文庙前开设粥棚，另熬枯草茶供饮，典史带各房衙役皂隶上街巡视，弹压民众。本来吴大令还想杀个人立威，被刘进士劝阻了，说此时不宜杀人，免得立威不成激起民变，不过板子打得更勤了，满街都能听到竹板着肉的劈啪声和倒霉蛋的惨叫求饶。老百姓在秋夜的寒风里一声不吭。
+The middle-aged man sneered, bent down to move the lantern, and said in a low voice, "Even if the pirates break the city, it will take more than a day to drain this well. It is extremely deep. Without this grapple, no one but a god could retrieve them."
 
-　　此时，城内靠北，县衙背后的一条窄巷内，有所宅院正亮着微微的灯光。院子里一片寂静。井口搁着一盏灯笼，灯笼边是几个铁箱。井台的青石条上坐着一男一女，呆呆地瞅着井台边一株高大的木棉，半晌不吱声。秋天的夜里已经是寒气逼人，都穿着毡子。
+He thought for a moment, then removed the iron parts of the grapple and hid them under the kapok tree, coiling the rope up again. He said to the woman, "Tomorrow morning, you take the family and go back to your parents' house. Chengxuan and I will stay in the city."
 
-　　男人用一幅绳索扣着箱子，一个一个的放下井去，待箱子入了水，再把绳扣抖开，只听得井内咕咚一响，便不见了踪影。
+"And you?"
 
-　　那妇人站在一旁起来，抖了抖长裙，终于开口了：“这里安全么？我想起了便心口发怵——这可是我们家几代人的积攒的……”
+"What are you afraid of? With my brothers to protect me, it won't be difficult to escape with my life even if the city falls. Chengxuan is a student at the county school; he can't leave. Magistrate Wu has had his eye on our family for a long time. If Chengxuan runs away, he will definitely use it as an excuse to strip him of his academic title."
 
-　　那中年汉子冷笑一声，弯腰将灯笼挪了挪，低声道：“贼人就是破城，要把这井淘干也不是朝夕的事情，下面极深，没有这幅抓扣，除非是神仙才能捞起来。”
+He stood up and clapped his hands. "I just had the Lai brothers send money to Magistrate Wu. I also donated twenty taels, and privately gifted another ten..."
 
-　　他想了想，将抓扣的铁件卸下藏在木棉树下，将绳子依旧卷了起来。对妇人道：“你明日一早，就带着家里头的人回娘家去，我和承绚留在城里。”
+"Thirty taels?!" the woman exclaimed, the pain evident on her face.
 
-　　“那你？”
+"Hehe, don't worry, wife." The man had a confident look on his face. "If the city doesn't fall, on account of these thirty taels, the contract for the autumn grain tax collection in the county's capital district will fall into my hands again, and the profit will be great. If the city falls..." he chuckled, "I have dozens of brothers. It won't be hard to pull a job in the chaos before we leave."
 
-　　“怕甚？有兄弟们维护，就算城破了要逃出命来也不难。承绚是县学的生员，走不得。吴老爷早看我们家不顺眼了，要是承绚跑了，铁定找这个由头革掉他的功名。”
-
-　　他站了起来，拍了拍手：“刚才我叫赖家兄弟去给吴令送钱了。我也捐二十两，私人又馈送了十两……”
-
-　　“三十两？！”妇人惊叫了一声，心疼之色浮于言表。
-
-　　“呵呵，夫人放心。”那汉子一脸笃定之色，“城若不破，看这三十两的面子上，今年县郭都的秋粮的包揽又能落到我手里，出息大了。若是城破了……”他嘿嘿一笑，“我手里有几十个兄弟，乘乱搞一票再出去也还不难。”
-
-　　他望着了无星月的夜空：“哼哼，我苟大户岂是那惊慌失措的平常之人？”
+He looked up at the starless, moonless night sky. "Hmph, how can I, Gou Dahù, be an ordinary person who panics?"
