--- a/_posts/2009-10-31-2-01400.md
+++ b/_posts/2009-10-31-2-01400.md
@@ -1,112 +1,114 @@
 ---
 layout: post
-title: 第十四节 侦察队
+title: "Section 14: The Reconnaissance Team"
 category: 2
 path: 2009-10-31-2-01400.md
 tag: [normal]
 ---
 
-　　“临高。”北炜拿着俄罗斯产的红外线望远镜，喃喃自语。红外望远镜下的景象有点模模糊糊的，但是大致轮廓都看得清。
+"Lingao," Bei Wei muttered to himself, holding a Russian-made infrared scope. The scene through the infrared scope was a bit blurry, but the general outline was clear.
 
-　　北炜过去也曾经踏遍了祖国的山山水水，从保留完整的山西平遥、湖南凤凰到仅剩下墙基的古城，见识过各种各样古代城池。但是像临高这样的县城还是第一次看到——椭圆形的，东西长，南北短。形象的说，像个橄榄。
+Bei Wei had traveled all over the country in the past, from the well-preserved ancient cities of Pingyao in Shanxi and Fenghuang in Hunan to ancient city ruins with only their foundations remaining. He had seen all kinds of ancient cities. But this was the first time he had seen a county town like Lingao—oval-shaped, long from east to west, and short from north to south. To put it vividly, it was like an olive.
 
-　　整座临高县城坐北朝南，背靠高山岭，面对文澜河。河流在这里自南弯曲向东北流去，形成一个拐弯，江水环保抱城池，“因河为池”，没有专门的护城河。
+The entire Lingao county town faced south, with its back to the Gaoshan Ridge and facing the Wenlan River. The river curved here from the south to the northeast, forming a bend. The river water surrounded the city, acting as a natural moat.
 
-　　目测城墙的高度，大约在7米左右。城周长很小，北炜估计也就1.5公里之间。小虽小，设防并不差，各城城门都有谯楼，似乎还有炮位，墙体全部包有砖石。明代在城市设防上是很舍得花人力物力的，就连这样的边陲小县都是壁垒森严。北炜想起自己旅游去过宇宙大国的一个古城遗址：乱石＋泥巴胡乱堆砌起来的所谓城墙还没自己读过书的小学的围墙高，城门就和火车路基下的过街隧洞一个样子。真不愧是周游世界向四大文明古国散布过文明火种最后退隐半岛上的宇宙第一大国。
+He estimated the height of the city walls to be about 7 meters. The circumference of the city was very small, Bei Wei estimated it to be around 1.5 kilometers. Although small, its defenses were not bad. Each city gate had a watchtower, and there seemed to be cannon positions. The entire wall was faced with bricks and stones. The Ming Dynasty was very willing to spend manpower and resources on urban defense; even a remote county like this was heavily fortified. Bei Wei thought of an ancient city site he had visited in the great cosmic nation of Korea: the so-called city wall, made of randomly piled stones and mud, was not even as high as the wall of the elementary school he had attended. The city gate was like an underpass beneath a railway embankment. Truly worthy of the number one cosmic power that had traveled the world spreading the seeds of civilization to the four great ancient civilizations before retreating to its peninsula.
 
-　　【注：明初临高县城初建时高仅一丈，嘉靖时为御倭寇，城墙增高至二丈，同时增修谯楼，并将城墙以砖石包砌】
+[Note: When Lingao county town was first built in the early Ming Dynasty, it was only one zhang high. During the Jiajing era, to defend against Japanese pirates, the city wall was raised to two zhang, watchtowers were added, and the wall was faced with bricks and stones.]
 
-　　此刻，从红外望远镜里可以看到城墙上篝火灯笼一个连一个，士兵们在来回走动巡逻，看起来守御很严密。不过，即使他这个从没研究过古代战争史的人，也看得出城门的设防有很大的漏洞。东西两门分处于橄榄的两端，完全向外凸出，两翼毫无掩护，攻击者完全可以集中猛攻尖端的城门，完全不必顾虑两翼的火力。至于面对文澜江的南门，又在整个‘橄榄’的中腰部最凸出处。
+At this moment, through the infrared scope, he could see a continuous line of bonfires and lanterns on the city wall. Soldiers were walking back and forth on patrol. The defense looked very tight. However, even he, who had never studied the history of ancient warfare, could see that the defense of the city gates had major flaws. The east and west gates were at the two ends of the olive, completely protruding outwards, with no cover on the flanks. An attacker could concentrate their attack on the tip of the gate without worrying about fire from the flanks. As for the south gate, which faced the Wenlan River, it was at the most prominent point in the middle of the 'olive'.
 
-　　东门外模模糊糊的有一些建筑，但是全无灯火，一片死寂。南城门外的文澜河上，还有一座长长的连拱石桥，这是永乐年间县丞陆昇在元代太平桥木桥的基础上改建而成，桥有九孔，名为临江桥。
+Outside the east gate, there were some blurry buildings, but there were no lights, and it was deathly silent. On the Wenlan River outside the south gate, there was a long stone arch bridge. This was the Linjiang Bridge, built on the foundation of the Yuan Dynasty's Taiping wooden bridge by the county adjutant Lu Sheng during the Yongle era. The bridge had nine arches.
 
-　　【注：此桥又名文水桥，清代整修，50年代被加高加宽，一直用到20世纪60年代末，1970年这座保存尚好的古桥被拆毁。】
+[Note: This bridge was also known as the Wenshui Bridge. It was renovated in the Qing Dynasty, raised and widened in the 1950s, and was used until the late 1960s. In 1970, this well-preserved ancient bridge was demolished.]
 
-　　“看来县里已经知道我们来了。”李军小声说。
+"It seems the county already knows we're here," Li Jun said in a low voice.
 
-　　“别说话，注意警戒。”北炜调整着望远镜的焦距。
+"Don't talk. Stay alert," Bei Wei said, adjusting the focus of his scope.
 
-　　黄昏的时候，[马千瞩][y005]找北炜，要他带一支精干的侦察队沿文澜河向内陆挺进，直插临高县城下。
+At dusk, [Ma Qianzhu][y005] had found Bei Wei and ordered him to lead an elite reconnaissance team to advance inland along the Wenlan River, straight to the outskirts of Lingao county town.
 
-　　“以最快动作插到临高城下，监视县城动静。”[马千瞩][y005]叮嘱他，“沿路的勘察不是你的任务。”
+"Advance to the outskirts of Lingao town with the fastest possible speed and monitor the county's movements," [Ma Qianzhu][y005] instructed him. "Surveying the route is not your mission."
 
-　　接到命令之后，他立刻从军事组抽调了3名刚休息过的人员，又从通讯组里调来1人。挑选了必要的装备稍做准备之后，在夜幕降临之后就出发了。
+After receiving the order, he immediately selected 3 members from the military group who had just rested and transferred 1 person from the communications group. After selecting the necessary equipment and making brief preparations, they set out as night fell.
 
-　　“你们的任务不是打仗，以监视对方动向为主，没有必要不要杀人。”
+"Your mission is not to fight, but to mainly monitor the enemy's movements. Do not kill unless necessary."
 
-　　根据这一任务性质，侦察队员都换上了迷彩服，除了步枪之外，还特意带了一支带瞄准镜的Saiga－308步枪，另携带红外望远镜和2瓦电台一部。
+According to the nature of this mission, the reconnaissance team members all changed into camouflage uniforms. In addition to their rifles, they also brought a Saiga-308 rifle with a scope, as well as an infrared scope and a 2-watt radio.
 
-　　夜间越野对一般人来说可能有些困难，对于军人来说并非难事。更不用说他们还每人装备了一副微光夜视镜。稍微困难的是手里没有这个时空的临高地图，行进途中很难判断自己的方位，因此北炜决定尽量沿着河走——按照本时空的地理资料，沿河上溯12公里就是临高县城，途中还有百仞滩这样明显的地标可以作为参考，再配合指北针和地图判读，没有向导也不会迷路。
+Night cross-country travel might be difficult for ordinary people, but it was not a difficult task for soldiers, not to mention that they were each equipped with a pair of low-light night vision goggles. The slight difficulty was that they did not have a map of Lingao from this time-space, making it difficult to determine their position during the march. Therefore, Bei Wei decided to follow the river as much as possible. According to the geographical data from their own time, Lingao county town was 12 kilometers upstream along the river. There were also obvious landmarks like Bairen Tan along the way that could be used as a reference. Combined with a compass and map reading, they would not get lost even without a guide.
 
-　　如果是一般的道路，12公里即使是普通人徒步3小时也能走到。眼下虽没有道路，但是参谋旅行的时候他们就发现，文澜河两岸基本没有复杂地形，最多有4个小时也够了。
+If it were a normal road, even an ordinary person could walk 12 kilometers in 3 hours. Although there was no road now, they had discovered during their staff tour that there was basically no complex terrain on either side of the Wenlan River. Four hours at most would be enough.
 
-　　实际上他们比自己想像的还要快，在佩戴夜视镜的情况下小队沿着河行军，一路上没有休息，3小时就已经看到临高县的灯火。
+In fact, they were even faster than they had imagined. The team marched along the river wearing night vision goggles, without resting along the way. In 3 hours, they could already see the lights of Lingao county town.
 
-　　隔江选择了一处小山坡，这里是一处杂木林，正处于县城南门与东门中间的位置，与城墙隔江相望，可以清楚的监视南门和东门。侦察队员们在这里构筑了观察阵地，又洒了驱逐蛇虫的药粉。9月的临高夜晚气温已经很低，露水很重，队员们用雨布搭起小棚子，开始轮班守候。
+They chose a small hill across the river. It was a grove of miscellaneous trees, located between the south and east gates of the county town, facing the city wall across the river. From here, they could clearly monitor the south and east gates. The reconnaissance team members set up an observation post here and sprinkled powder to repel snakes and insects. The temperature in Lingao at night in September was already very low, and the dew was heavy. The team members used a tarp to set up a small shelter and began to take turns on watch.
 
-　　“队长，指挥部叫通了，要我们汇报情况。”担任报务员的李运兴报告。
+"Captain, I've reached the command post. They want us to report the situation," reported Li Yunxing, the radio operator.
 
-　　“这是北炜在电报机旁。”
+"This is Bei Wei at the radio."
 
-　　“这是[马千瞩][y005]在电报机旁，你们情况怎么样？”
+"This is [Ma Qianzhu][y005] at the radio. What is your situation?"
 
-　　“很好。侦察队于农历9月1日21时12分抵达临高，”北炜低头看了下自己的手表，“目前正在观察中。”
+"Very good. The reconnaissance team arrived at Lingao at 21:12 on the first day of the ninth lunar month," Bei Wei said, looking down at his watch. "We are currently observing."
 
-　　“临高目前的情况怎么样？”
+"What is the current situation in Lingao?"
 
-　　“已经进入戒备状态，自西向东的南城墙上有大约20人在巡逻站岗。”
+"They have entered a state of alert. There are about 20 people patrolling and standing guard on the south city wall from west to east."
 
-　　“继续监视，有情况随时联系，完毕。”[马千瞩][y005]结束了通话，抬头看了下船上的钟，时针已经指向晚上九点半，D日T时已经过去了十多个小时，卸下了大批物资和装备，海滩基地也初具规模。现在的营地已足以抵御几百名当地武装的攻击，然而各处传来的报告并不乐观，一些基本建筑材料奇缺，花费了许多工时建成的设施多半是临时建筑，许多基本民生设施也无法到位。
+"Continue to monitor. Contact us at any time if there is a situation. Over." [Ma Qianzhu][y005] ended the call, looked up at the clock on the ship. The hour hand was already pointing to 9:30 PM. More than ten hours had passed since D-Day T-hour. A large amount of materials and equipment had been unloaded, and the beach base was beginning to take shape. The current camp was sufficient to withstand an attack by several hundred local armed forces. However, the reports from various places were not optimistic. There was a severe shortage of some basic building materials, and the facilities built with many man-hours were mostly temporary. Many basic civil facilities could not be put in place.
 
-　　与当地人接触方面为0，警戒线上的军事组人员虽然发现了大量人类活动的痕迹，但暂时还没遇到过当地人。烽火台上的瞭望哨发现海面时而有少量帆船过往，但是作为临高渔民的主要渔场昌拱湾附近却没有一条渔船出现，显然是给烽火台的报警吓跑了。
+Contact with the locals was zero. Although the military group personnel on the perimeter had found a large number of traces of human activity, they had not yet encountered any locals. The lookout on the beacon tower found that a small number of sailing boats passed by on the sea from time to time, but there was not a single fishing boat in the vicinity of Chang'gong Bay, which was the main fishing ground for Lingao fishermen. They had obviously been scared away by the beacon alarm.
 
-　　在第一天的总结会议上，许多执委都认为原先计划的乌龟流战略太过保守，D日的发生的一切证明蜗在博铺港不利于基地的升级。眼下的状态，按[王洛宾][y003]的说法就是一个死循环：没有足够建筑材料－不能建造生产基地－没有生产基地－生产不了建筑材料－没有足够的建筑材料。要突破这个循环，就得迅速的走出去，在适合发展的地方建立起工业基地。
+At the summary meeting on the first day, many executive committee members believed that the original "turtle" strategy was too conservative. Everything that happened on D-Day proved that hunkering down in Bopu Port was not conducive to upgrading the base. The current state, in [Wang Luobin][y003]'s words, was a vicious cycle: no sufficient building materials -> cannot build a production base -> no production base -> cannot produce building materials -> no sufficient building materials. To break this cycle, they had to go out quickly and establish an industrial base in a suitable place for development.
 
-　　从侦察队传来的消息看，当地人现在惊慌失措，只是闭门自守，根本不会来袭击穿越者。正是迅速扩大控制范围，升级基地的好机会。
+From the news from the reconnaissance team, the locals were now in a panic and were just closing their doors to defend themselves. They would not come to attack the transmigrators at all. This was a good opportunity to quickly expand the control area and upgrade the base.
 
-　　会议做出决议，明天天一亮，派出第二支侦察队，任务是对临近地区的地形进行测绘和资源勘察。
+The meeting made a resolution that at dawn tomorrow, a second reconnaissance team would be sent out to survey the terrain and resources of the nearby area.
 
-　　“同时还要再派出一支线路勘测队，勘测设计博铺—百仞滩公路。”[文德嗣][y002]的彩色铅笔在地图的透明板上划了一条线，“我们边勘探边设计边施工，除了保持必要的人力和设备继续卸货之外的全部劳动力、机械都投入这个工程。争取在三四天时间内打通两地之间的联系，这样到D+5我们就可以在百仞滩展开建设工作。”
+"At the same time, we need to send out another route survey team to survey and design the Bopu-Bairen Tan highway," [Wen Desi][y002] drew a line on the transparent sheet on the map with a colored pencil. "We will survey, design, and construct at the same time. Except for maintaining the necessary manpower and equipment to continue unloading, all other labor and machinery will be invested in this project. We will strive to open up the connection between the two places within three or four days, so that by D+5 we can start construction work at Bairen Tan."
 
-　　“两支勘测队都要军事组执行保卫任务吧？”何鸣问，“军事组得申请增召十名民兵进入现役。”
+"Both survey teams will need the military group to perform security tasks, right?" He Ming asked. "The military group will have to apply to activate ten more militiamen into active service."
 
-　　[文德嗣][y002]眉头紧皱，眼下人力资源相当吃紧，一旦开始筑路，不用说劳动力更缺。但是军事组也的确到了捉襟肘见的地步，二十一个人要负责陆地和海上的警戒、瞭望，一天下来没休息又派出了四个去侦察，其他人现在还在各个塔楼和哨位上——他们只能轮流打盹。
+[Wen Desi][y002]'s brow furrowed. Manpower was very tight at the moment. Once road construction began, there would be an even greater shortage of labor. But the military group was indeed stretched to its limit. Twenty-one people were responsible for land and sea security and observation. After a whole day without rest, four had been sent out for reconnaissance, and the others were still at various towers and posts—they could only take turns napping.
 
-　　“好吧，人可以给你。”[文德嗣][y002]下了决心，“每个测绘勘测队各派二名警卫。”他看了一眼何鸣，“这样问题不大吧？”
+"Alright, you can have the men," [Wen Desi][y002] made up his mind. "Each survey and reconnaissance team will be assigned two guards." He glanced at He Ming. "That shouldn't be a problem, right?"
 
-　　何鸣点点头：“没问题，组织上现在劳动力紧张，军事组人员不执勤的时候也要参加劳动。”
+He Ming nodded. "No problem. The organization is short on labor right now. When the military group personnel are not on duty, they will also participate in labor."
 
-　　“你们一天警戒下来，也很辛苦的。”
+"You guys have worked hard after a whole day of guard duty."
 
-　　“我和白羽、邬德、陈海阳他们都商量过，调整一下军事组的执勤方案，担任警戒任务的每人每天必需抽2小时劳动，我带头。”
+"I've discussed it with Bai Yu, Wu De, and Chen Haiyang. We'll adjust the military group's duty schedule. Everyone on security duty must work for 2 hours a day. I'll take the lead."
 
-　　天色渐渐发亮，D＋1日的凌晨降临在第一侦察队的身上，每个人身上披着伪装斗篷，露水让他们浑身都湿漉漉。
+***
 
-　　望远镜里能看到城头上的人一边打哈欠一边在把灯笼取下熄灭，火把的火都熄灭了，在晨曦中散发着袅袅青烟。
+The sky gradually brightened. The dawn of D+1 descended on the first reconnaissance team. Everyone was wearing a camouflage cloak, and the dew had made them all damp.
 
-　　晚上看到东门外模模糊糊的建筑，原来都是些庙宇之类的建筑。城池周边都是开阔地，有大片的荒野，夹杂着一些水田，期间还散落着几处民居聚落。
+Through the binoculars, they could see people on the city wall yawning as they took down and extinguished the lanterns. The flames of the torches had all gone out, emitting wisps of green smoke in the morning light.
 
-　　魏爱文慢慢爬到李军的观察位置，说道：“李哥，咱们动手吧。”
+The blurry buildings they had seen outside the east gate at night turned out to be some temples. The area around the city was open land, with large patches of wilderness interspersed with some paddy fields. There were also a few scattered residential settlements.
 
-　　“你想干吗？”
+Wei Aiwen slowly crawled to Li Jun's observation position and said, "Brother Li, let's make a move."
 
-　　“打进县城去呀。”
+"What do you want to do?"
 
-　　“就我们五个人？”李军扫了一眼正在伪装棚下睡觉的三个人。这小魏还真是个左倾冒险主义分子。
+"Charge into the county town."
 
-　　“我们五条半自动，还怕他几个土人？冲上去一顿子弹就把他们都吓跑了。”
+"Just the five of us?" Li Jun glanced at the three people sleeping under the camouflage shelter. This Little Wei was really a left-wing adventurist.
 
-　　“那你先去穿雨衣吧。”
+"We have five semi-automatic rifles. Are we afraid of a few natives? We'll rush up and a volley of bullets will scare them all away."
 
-　　“为什么？”
+"Then you should go put on your raincoat first."
 
-　　“穿成咱们这样，肯定会被当成妖人泼狗血、大便的。”
+"Why?"
 
-　　“……”魏爱文本来也知道这是不可能的，他的真实想法是开开枪荤，SKS拿到手之后，他死皮赖脸的要到了一个俄罗斯产的R14瞄准镜，又缠着北炜帮他练习，昨天警戒的时候已经“空发”了好几十次，今天正巴不得找个机会试试枪法。
+"Dressed like us, we'll definitely be treated as demons and have dog's blood and feces thrown at us."
 
-　　北炜被他们的话吵醒了，说：“省省吧，执委会给我们的任务是侦察不是打仗，冒然开枪会暴露我们的企图，再说这次的目的一是侦察，二是锻炼锻炼队伍。你不是一到这里就累趴下了，睡了大半宿才醒的。”
+"..." Wei Aiwen knew this was impossible. His real intention was to get his first taste of firing a gun. After getting his SKS, he had pestered for a Russian-made R14 scope and had also pestered Bei Wei to help him practice. He had already "dry-fired" dozens of times while on guard yesterday, and today he was eager to find an opportunity to test his marksmanship.
 
-　　“我可是替你顶了半宿的，你要记得下次还我。”李军说，“我可是三十好几的人了，值夜班伤身体啊……”
+Bei Wei was awakened by their conversation. He said, "Save it. The Executive Committee's mission for us is reconnaissance, not fighting. Firing rashly will expose our intentions. Besides, the purpose of this mission is, one, reconnaissance, and two, to train the team. Weren't you the one who collapsed from exhaustion as soon as you got here and slept for most of the night before waking up?"
+
+"I covered for you for half the night. You have to remember to pay me back next time," Li Jun said. "I'm in my thirties. Working the night shift is bad for my health..."
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
 [y005]: /characters/y005 "马千瞩"
