--- a/_posts/2009-10-5-1-03500.md
+++ b/_posts/2009-10-5-1-03500.md
@@ -1,103 +1,103 @@
 ---
 layout: post
-title: 第三十五节 余波
+title: "Section 35: The Aftermath"
 category: 1
 path: 2009-10-5-1-03500.md
 tag: [normal]
 ---
 
-　　营救行动给百无聊赖的穿越众们带来了无尽的话题。给这漫长枯燥的准备工作打了一针兴奋剂。参加行动的几个人每天晚上下班之后都被人揪着要求说说他们已经重复了几百次的事情。北炜、冉耀和林深河犹如夜幕中升起的三颗新星般闪闪发亮。走到哪都有人来寒暄打招呼，不认得的人也来称兄道弟。
+The rescue operation provided endless conversation topics for the bored transmigrators, injecting a shot of excitement into the long and tedious preparations. Every evening after work, the participants were cornered and asked to recount the story they had already told hundreds of times. Bei Wei, Ran Yao, and Lin Shenhe shone like three new stars rising in the night sky. Everywhere they went, people greeted them, and even strangers would approach them like old brothers.
 
-　　[文德嗣][y002]经过入院全面检查，医生得出的结论是被许多人倍加呵护的送到医院来的这个人比其他人都要健康的多。虽然丢了一些东西，也不过是无关紧要的物品。最有价值的无非就是[文总][y002]的防刺背心和电击器了，有人浪漫得想到了防刺背心会不会成为江湖传说中的天蚕宝甲，更有人异想天开的建议执委会批发“天蚕宝甲”——一万两一件。
+After a thorough medical examination, the doctors concluded that [Wen Desi][y002], who had been brought to the hospital with great care by many, was healthier than anyone else. Although he had lost some items, they were insignificant. The most valuable were [Director Wen][y002]'s anti-stab vest and stun gun. Some romantically imagined the vest becoming a legendary "celestial silk armor," while others fantastically suggested the Executive Committee should mass-produce and sell them for ten thousand taels of silver apiece.
 
-　　执委会的情绪却没有这么乐观。当然他们不是担心什么宝甲或是电击器。防刺背心是档不住子弹的，电击器的电池没电了也就是一塑料壳子。而是这次绑票带出来的幕后讯息。
+The mood in the Executive Committee, however, was not so optimistic. Of course, they weren't worried about any legendary armor or the stun gun. The vest couldn't stop a bullet, and the stun gun was just a plastic shell once its battery died. They were concerned about the information uncovered by the kidnapping.
 
-　　从几个击毙的匪人身上搜到的东西零零碎碎，银子、铜钱、火石、烟袋什么都有，最有价值的是一封书信，内容倒也平淡无奇：无非是问安，询问托付货物是否已销之类的事情，但是落款居然是“闽安周瑞顿首”。
+The items found on the dead bandits were a motley collection of silver, copper coins, flint, and tobacco pouches. The most valuable item was a letter. Its content was unremarkable: simple greetings and inquiries about whether entrusted goods had been sold. But the signature was "Respectfully, Zhou Rui of Min'an."
 
-　　要不是已经来了帝都穿越党，青年历史研究生于鄂水——注意不是青年历史学者，这封信大约也就这么滑过去了，于同学看了之后告诉执委会，这个闽安的周瑞应该就是郑芝龙的族弟郑彩（一说族侄）的“义男”。
+If it weren't for the presence of Yu E'shui, a young history graduate student from the capital, this letter might have been overlooked. After reading it, Yu informed the committee that this Zhou Rui of Min'an was likely an "adopted son" of Zheng Cai, a cousin (or by some accounts, a nephew) of the infamous Zheng Zhilong.
 
-　　所谓“义男”是当时中国海贸商人中常见的经营方式。出海贸易风险较大，豪门巨室便豢养一些义男、义儿，让他们顶风破浪出海贸易，而自己的亲生儿子则可以在家坐享其成。还有些人则是因为负债沦为“义男”、“义儿”。这些义男义儿社会地位不高，等于是商业性的半奴隶——终身职业经理人，还不准跳槽。郑氏家族蓄养了大量这样“职业经理人”，后来郑成功手下赫赫有名的户官郑泰，也是这样的义男。
+The "adopted son" system was a common business practice among Chinese maritime merchants at the time. Sea trade was risky, so powerful families would raise these "adopted sons" to brave the waves and conduct trade, while their own biological sons could enjoy the profits at home. Some became "adopted sons" due to debt. These men had low social status, effectively serving as commercial semi-slaves—lifelong professional managers who weren't allowed to switch employers. The Zheng family maintained a large number of such "professional managers." Zheng Tai, who later became a famous finance official under Koxinga (Zheng Chenggong), was also one such adopted son.
 
-　　郑彩，用现代话来说就是长期在郑芝龙集团内占据主要领导岗位。此人虽在郑家属于旁干支系，但是郑芝龙降清之后被挟持而去，一时间郑氏集团群龙无首，他能独树一帜，退居厦门与郑成功抗衡。势力相当可观。
+Zheng Cai, in modern terms, held a major leadership position within the Zheng Zhilong group for a long time. Although he was from a collateral branch of the Zheng family, after Zheng Zhilong surrendered to the Qing and was taken away, the Zheng group was left leaderless. Zheng Cai managed to establish his own faction, retreating to Xiamen to contend with Zheng Chenggong. His power was considerable.
 
-　　这个王姓匪首身上有郑家职业经理人的信，很多讯息又表明他们是闽南一带地方的人，郑芝龙的影子便清清楚楚的浮现出来。
+The fact that the bandit leader had a letter from one of the Zheng family's professional managers, combined with other information indicating they were from the southern Fujian region, made the shadow of Zheng Zhilong loom large and clear.
 
-　　还没正式开始穿就和明末清初的中国最大海上集团郑家结下梁子，这事可不大好玩。
+To have made an enemy of the Zheng family, the largest maritime group in late Ming and early Qing China, before they had even officially begun their venture, was not a pleasant prospect.
 
-　　于鄂水对忧心忡忡的执委会成员说：这是杞人忧天。晚明的广东福建洋面上海盗如毛，除去郑家这伙人马，史学界目前叫得出名的海盗/海商团伙就有一二十股，没名没姓的小海盗，见财起意，随时随地捞一票的海商，外加荷兰英国葡萄牙……简直就是丛林法则的乐园。穿越众要在海南立住脚，非把他们都打服了不可。和谁结仇，早结仇晚结仇，最后都是一码事。这种亦商亦盗的人物可不管你和他有没有仇，有钱赚他就要来插一脚，没实力就会被他抢，和平的贸易关系完全建立在彼此武力的威慑下。所以这次打了也没什么不好，起码让他们知道穿越者不是好惹的，以后才不会这么肆无忌惮。
+Yu E'shui told the worried committee members that they were worrying unnecessarily. The seas off Guangdong and Fujian in the late Ming were teeming with pirates. Besides the Zheng group, historians could name at least a dozen other major pirate/merchant gangs. There were also countless smaller, nameless pirates and sea merchants who would turn to piracy whenever an opportunity for profit arose, not to mention the Dutch, English, and Portuguese... it was a paradise of jungle law. For the transmigrators to establish a foothold on Hainan, they would have to subdue all of them. Who they made an enemy of, and whether it was sooner or later, would ultimately amount to the same thing. These merchant-pirates didn't care if you were an enemy or not; if there was money to be made, they would get involved. If you were weak, you would be robbed. Peaceful trade relations were built entirely on the foundation of mutual military deterrence. Therefore, this fight wasn't a bad thing. At the very least, it showed them that the transmigrators were not to be trifled with, which might make them less reckless in the future.
 
-　　虽说如此，执委会为了防备郑家可能的报复行动，还是在广州据点内进行了一级戒备。改建了住房，安装了栅栏和防盗门，还储备了若干灭火器。
+Despite this reasoning, the Executive Committee still placed the Guangzhou outpost on high alert to guard against possible retaliation from the Zheng family. They renovated the living quarters, installed bars and security doors, and stockpiled a number of fire extinguishers.
 
-　　[萧子山][y001]去拜会了高举，把事情经过大致告知了一番，把个高老爷听得惊诧不已——没想到澳洲海商还有这一手，在这人生地不熟的地方干净利落的了解了此事。事情出来之后，虽然也应[萧子山][y001]的要求派过轿子骡车供他们使用，却一直有些拿捏，不肯全力帮忙——原打算赎票的信来了之后等他们求教上门，这样可以卖个大大的人情。
+[Xiao Zishan][y001] paid a visit to Gao Ju and roughly informed him of what had happened. Master Gao was astonished—he had never expected the Australian sea merchants to have such capabilities, cleanly resolving the matter in a place where they were complete strangers. After the incident occurred, although he had provided sedan chairs and mule carts at [Xiao Zishan][y001]'s request, he had been holding back, unwilling to offer his full assistance. His original plan was to wait for the ransom note to arrive and for them to beg for his help, allowing him to earn a huge favor.
 
-　　没想到这伙澳洲海商如此强悍！他不由得大大懊恼。[萧子山][y001]开口请他帮忙，忙不迭的就满口答应下来。
+He never imagined this group of Australian sea merchants would be so formidable! He was filled with regret. When [Xiao Zishan][y001] asked for his help, he agreed immediately and profusely.
 
-　　[萧子山][y001]以此事之后，那所宅子容易受到袭击为借口，提出要另外再买房屋。高举无奈，只好答应。好在买屋子的事情还是由他经手，澳洲人似乎也没丧失对他的信任。于是连拍胸脯，说连房款都可代付——算做为[文老爷][y002]压惊的礼物，[萧子山][y001]连说了几句：“下不为例，下不为例”笑纳了。
+Citing the residence's vulnerability to attack after the incident, [Xiao Zishan][y001] proposed buying another house. Gao Ju had no choice but to agree. Fortunately, he was still handling the purchase, so it seemed the Australians hadn't lost their trust in him. He beat his chest and promised to even pay for the house himself—as a gift to calm [Master Wen][y002]'s nerves. [Xiao Zishan][y001] repeated, "This won't set a precedent, this won't set a precedent," as he graciously accepted.
 
-　　说着，高老爷又拿出一张单子，递给了[萧子山][y001]。
+Then, Master Gao produced a list and handed it to [Xiao Zishan][y001].
 
-　　他打开一看，上面开列着：纸卷淡巴菰一万支、乌银打火机二百个、鹅蛋镜三十面、粉盒镜二百个、等身穿衣镜二面、各式新奇澳货不拘。
+He opened it and read: ten thousand paper-rolled cigarettes, two hundred nickel-silver lighters, thirty goose-egg-sized mirrors, two hundred powder-case mirrors, two full-length dressing mirrors, and an assortment of other novel Australian goods.
 
-　　“这是？”
+"What is this?"
 
-　　“唉！”高老爷叹了一声，脸上露出十分肉痛的表情，“是在下在京里的一点孝敬。急用，兄弟能在一旬内送来么？”
+"Alas!" Master Gao sighed, a pained expression on his face. "It's a small tribute from me to someone in the capital. It's urgent. Can you, my brother, deliver it within ten days?"
 
-　　“好说，好说。”[萧子山][y001]满口答应，这又不是什么稀罕东西，除了香烟，其他的去次小商品市场就行了。不过这份孝敬真得不小，合起贸易金额来说，高老爷得付差不多二万两的货款。什么人这么牛B？
+"Of course, of course," [Xiao Zishan][y001] readily agreed. These weren't rare items. Apart from the cigarettes, the rest could be sourced from a small commodities market. But this was no small tribute; in terms of trade value, Master Gao would have to pay nearly twenty thousand taels of silver. Who was this powerful person?
 
-　　[萧子山][y001]想这样强势的人物，如果能通过高老爷搭上一条线，以后也有用得上的机会。便故意说：“这咱们自然要带些新奇的物件过来。不知道朝中大佬有什么嗜好？咱们给他来个投其所好，岂不是更好。”
+[Xiao Zishan][y001] thought that if he could establish a connection with such a powerful figure through Master Gao, it could be useful in the future. He deliberately said, "We will naturally bring some novel items. I wonder what hobbies the great official in the court has? If we cater to his tastes, wouldn't that be even better?"
 
-　　“多谢贤弟了，”高老爷苦笑了一下，“新奇货自然要有，这些东西，是他们指明要的。”
+"Thank you, my worthy brother," Master Gao said with a bitter smile. "Novel goods are a must, of course, but these items are what they specifically requested."
 
-　　真TMD腐败。[萧子山][y001]心里骂了一句，受贿不算还索贿，索贿还带点名要什么东西。
+*So damn corrupt,* [Xiao Zishan][y001] cursed inwardly. Not only accepting bribes but soliciting them, and even specifying what they wanted.
 
-　　“那要得了这许多？”他故作惊讶。
+"But why do they need so many?" he asked, feigning surprise.
 
-　　“也不多，宫里头的二位、二十四衙门、内阁相公们……”高举喃喃说着又打住了，“忘了贤弟不是大明人士了，这些说了也未必闹得清楚。”
+"It's not that many. The two in the palace, the twenty-four offices, the grand secretaries of the cabinet..." Gao Ju muttered before stopping himself. "I forgot you are not a subject of the Great Ming. It might be hard for you to understand all this."
 
-　　[萧子山][y001]听得很仔细，这送礼的级别还真不低。高举有这么大的能量？有心想试探一下，便悄声问：“这位开单子的大人，莫不是九千岁？”
+[Xiao Zishan][y001] listened carefully. The level of this gift-giving was indeed high. Did Gao Ju have such powerful connections? He decided to probe a little and asked in a low voice, "Could this official who made the list be the Nine Thousand Year Old?"
 
-　　高举吓了一跳，忙往四面一看，见并无他人，才小声答道：
+Gao Ju was startled. He quickly looked around, and seeing no one else, he whispered back:
 
-　　“慎言！不是厂公，乃是另外一位。”他反问道，“贤弟怎么知道九千岁的名头？”
+"Be careful with your words! It's not the Director of the Eastern Depot, but another one." He then asked, "How do you know the title of the Nine Thousand Year Old?"
 
-　　“来大明这许久，大明的事情也多少知道一点。”[萧子山][y001]做出一幅意味深长，“我知道的比说出来还要多”的神气来，猛吊他的胃口。
+"Having been in the Great Ming for so long, I've learned a thing or two about its affairs," [Xiao Zishan][y001] said, putting on a profound expression that suggested, "I know more than I let on," to whet his appetite.
 
-　　高举果然接招：“兄弟你也知道哥哥我做得是什么买卖，”他叹了一声，“这买卖能太太平平的做到现在，都是托了宫里一位杨公公的福。”
+Gao Ju took the bait. "Brother, you know what kind of business I'm in," he sighed. "The reason this business has been able to operate peacefully until now is all thanks to a Eunuch Yang in the palace."
 
-　　当下把和杨公公的关系大略说了一番，无非就是杨公公是他的靠山，分赃的事情自然没说，[萧子山][y001]想也想得出来——这种关系只要是中国人没有想不到的，哪怕你再说和他是纯洁的朋友关系也没用。
+He then briefly explained his relationship with Eunuch Yang. In short, Eunuch Yang was his backer. He naturally didn't mention the part about sharing the profits, but [Xiao Zishan][y001] could easily imagine it—any Chinese person could understand such a relationship, even if you claimed it was a purely platonic friendship.
 
-　　“可如今杨公公在宫里大不如前了。”高举又低声起来，声音低得和蚊子差不多，“不为厂公所喜。”
+"But now, Eunuch Yang's position in the palace is not what it used to be," Gao Ju whispered, his voice as low as a mosquito's buzz. "He is not favored by the Director of the Eastern Depot."
 
-　　“这批物件，就是要去讨取欢心了？”
+"So this batch of goods is to win back favor?"
 
-　　“哪敢说欢心，四面烧香，求个平安就是上上签了。”高举擦了一把额头上的汗，“我和杨公公实为一体，花费再多也得尽力报效。”
+"I wouldn't dare say win favor. Burning incense in all directions and praying for peace is the best I can hope for." Gao Ju wiped the sweat from his forehead. "Eunuch Yang and I are in the same boat. No matter the cost, I must do my best to serve him."
 
-　　“兄弟省得了。”
+"I understand, brother."
 
-　　“还有一事，也请兄弟帮忙，”高举拱了拱手。
+"There is one more matter I need your help with, brother," Gao Ju said, cupping his hands.
 
-　　“好说，好说。”[萧子山][y001]想他的面容这么诚恳，语气如此真挚，难道是要借钱？！
+"Of course, of course." [Xiao Zishan][y001] thought, *His expression is so sincere, his tone so earnest. Is he going to ask to borrow money?!*
 
-　　“近来我有一烦难之事，银钱恐会周转不灵……”
+"Recently, I have a difficult matter, and my funds may be tight..."
 
-　　TMD，真是怕啥来啥，[萧子山][y001]还在点头微笑，笑容却开始僵硬了。
+*Damn it, what you fear is what you get.* [Xiao Zishan][y001] was still nodding and smiling, but his smile began to stiffen.
 
-　　“……想烦请贤弟说合澳洲的几位掌柜，能否改成每月一次结账？若能说合，兄长我感激不尽，另有酬谢。”
+"...I would like to trouble you, my worthy brother, to persuade the other Australian shopkeepers to switch to a monthly payment settlement. If you can arrange this, I will be eternally grateful and will reward you separately."
 
-　　这是想要赊欠，居然还想要贿赂俺。[萧子山][y001]想，高举提出这个条件，放在任何一个时空来说也不算过。21世纪的多数企业做梦都要笑出来：每月一结放在月结60天已经是公认规则，宝岛商家还在努力推行120天的。而17－19世纪早期的外商到中国贸易，货物委托给中国商人之后一二年后才能结款，还经常结不到账，引发许多中外贸易冲突。
+*So he wants credit, and he's even trying to bribe me,* [Xiao Zishan][y001] thought. Gao Ju's request wasn't unreasonable in any era. Most 21st-century companies would be dreaming: monthly settlement was a godsend when 60-day terms were the norm, and Taiwanese merchants were pushing for 120 days. In the early 17th-19th centuries, foreign merchants trading in China often had to wait one or two years after entrusting their goods to Chinese merchants to get paid, and often they wouldn't get paid at all, leading to many trade disputes.
 
-　　问题是他们的穿越贸易为得是尽快筹集钱款，赊欠会增加收款的不稳定性，这事执委会未必会同意。
+The problem was that their trans-temporal trade was aimed at raising funds as quickly as possible. Extending credit would increase the instability of their collections, and the Executive Committee was unlikely to agree.
 
-　　他忽然意识到，从刚才起，高老爷就一直在操纵谈话，利用他的好奇心一步一步的把话题引到这上面的——这个老狐狸！
+He suddenly realized that, from the beginning of the conversation, Master Gao had been manipulating it, using his curiosity to steer the topic step-by-step to this point—this old fox!
 
-　　“莫非贤弟很为难？”高举看他表情变化，知道事情难办。
+"Is this very difficult for you, my worthy brother?" Gao Ju saw the change in his expression and knew it would be a hard sell.
 
-　　“此事须得从长计议。”事已至此，他也只好委以虚蛇，“只是要赊欠货物，须得有明确的缘由，我们才能评议可否。”
+"This matter requires careful consideration." Since it had come to this, he had to play along. "But if we are to extend credit, there must be a clear reason, so we can evaluate whether it's feasible."
 
-　　迟疑了一下，高举便把杨天梁来广州，和他商议建造九千岁生祠的事情一一都说了。
+After a moment's hesitation, Gao Ju told him everything about Yang Tianliang coming to Guangzhou and discussing the construction of a living shrine for the Nine Thousand Year Old.
 
-　　“这生祠本来好说，拼着费上五千两银子也够了。可杨公公的意思是要‘规模闳丽’，还要发动广州的商民，这事情里里外外的花费恐怕没个七八万两下不来。”高举面孔在微微抽搐，显然肉痛之极。
+"The living shrine itself would have been manageable. Five thousand taels of silver would have been enough. But Eunuch Yang wants it to be 'grand and magnificent' and wants to mobilize the merchants and citizens of Guangzhou. The total cost, inside and out, will likely be no less than seventy or eighty thousand taels." Gao Ju's face twitched, clearly in extreme pain at the thought of the expense.
 
-　　[萧子山][y001]对九千岁生祠的知识完全来自中学里的《五人墓碑记》，广州有没有修过魏忠贤的生祠是毫无概念的，也不感兴趣。但是这事情还是要尽快汇报给执委会，让于于鄂水看看有没有利用的价值。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+[Xiao Zishan][y001]'s knowledge of the Nine Thousand Year Old's living shrines came entirely from the middle school text "The Five Man Grave Stone." He had no idea if a living shrine for Wei Zhongxian had ever been built in Guangzhou, nor was he interested. However, this matter needed to be reported to the Executive Committee as soon as possible, so Yu E'shui could see if there was any value to be exploited.
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
