--- a/_posts/2009-10-9-1-03900.md
+++ b/_posts/2009-10-9-1-03900.md
@@ -1,136 +1,138 @@
 ---
 layout: post
-title: 第三十九节 初来乍到
+title: "Section 39: Newly Arrived"
 category: 1
 path: 2009-10-9-1-03900.md
 tag: [normal]
 ---
 
-　　回基地的车上来[萧子山][y001]和来的四个人“今天天气哈哈哈”了一路，期间有人企图问点什么，[萧子山][y001]马上介绍起开车司机如何的干活卖力，价格低廉，开黑车也不好赚钱之类，言下之意就是在外人面前少说废话。
+On the car ride back to the base, [Xiao Zishan][y001] made small talk with the four newcomers, chatting about the weather. Whenever someone tried to ask a substantive question, [Xiao Zishan][y001] would immediately start talking about how hard the driver worked, how low his prices were, and how difficult it was to make a living as an unlicensed taxi driver, the subtext being: *don't talk nonsense in front of an outsider.*
 
-　　孟贤从车上下来，深深的呼吸了一口清新的空气，这地方环境还不错啊。转头看那边已经来了三四个身着作训服的年青人，一起帮忙卸起了行李。
+Meng Xian got out of the car and took a deep breath of fresh air. The environment here wasn't bad at all. He turned his head and saw three or four young men in training uniforms already there, helping to unload the luggage.
 
-　　四位新人被迎进了宿舍，宿舍还保留着当年部队营房的结构，虽然有些破损，用起来还方便。房间里放着三张铁架双人床，军毯、凉席、拖鞋、脸盆、口杯牙刷、毛巾基本用品一应俱全，看起来颇为精心。
+The four newcomers were welcomed into the dormitory. The dorm retained the structure of the old military barracks. Although somewhat dilapidated, it was still convenient to use. The room contained three iron-framed bunk beds, and basic necessities like military blankets, sleeping mats, slippers, washbasins, cups, toothbrushes, and towels were all provided, showing a considerable degree of care.
 
-　　“大家都坐、坐，”[萧子山][y001]满面笑容，学着电影里领导的派头把手摆了摆，“生活条件有点艰苦，希望大家能习惯。呵呵，毕竟我们要去的地方更艰苦。”
+"Everyone, please sit, sit," [Xiao Zishan][y001] said with a broad smile, waving his hand in the manner of a leader from the movies. "The living conditions are a bit spartan, I hope everyone can get used to it. Hehe, after all, the place we're going to is even tougher."
 
-　　“比我想象的要好多了。”自称叫田九九的眼镜兄打量了四周。
+"It's much better than I imagined," said the bespectacled man who introduced himself as Tian Jiujiu, looking around.
 
-　　“尽量让大家能住的习惯点，毕竟D日还有一段时间。养精蓄锐才能有好的状态。”[萧子山][y001]接着说，“大家一会去一号楼的登记报到。”
+"We try to make it as comfortable as possible for everyone. After all, there's still some time before D-Day. We need to be well-rested to be in good shape," [Xiao Zishan][y001] continued. "In a moment, everyone please go to Building One to register."
 
-　　接下来的几个小时里，先是在电脑上填写了一张个人状况登记表，无非是姓名、出生年月、学历、专业、工作经历、获得过的各种技能和专业证书之类的。比较详细的是特长栏目，这张电子表格对特长的规划非常细，涉及十三个大类，百来个项目，每个特长还有不同的能力程度。[萧子山][y001]在旁指点他们填表，而且一再要求要尽量准确仔细。还有兴趣爱好，也分得很细。以至于每个人都花了差不多二十分钟才填完。接着，他们被带到了医务室，一个专家模样的白大褂查核了他们在各地体检中心做的体检表——每个人来之前都在当地按要求做了全套详尽的体检。这些医疗资讯也被逐一输入电脑。他们还要提交自己在当地防疫站按执委会的要求做的各项免疫的完成证明。期间这位白大褂反复提醒他们：这是生死攸关的事情，不要隐瞒，没按要求完成的，可以在当地补种。
+For the next few hours, they first filled out a personal status registration form on a computer. It was the usual stuff: name, date of birth, education, major, work experience, and various skills and professional certificates. The section on special skills was particularly detailed. The electronic form broke down skills into thirteen major categories and over a hundred items, with different proficiency levels for each skill. [Xiao Zishan][y001] was there to guide them, repeatedly urging them to be as accurate and detailed as possible. There was also a section for hobbies and interests, which was also very detailed. It took each person almost twenty minutes to complete the form. Next, they were taken to the infirmary, where an expert-looking man in a white coat checked the medical examination reports they had brought from their local check-up centers—everyone had been required to undergo a full, detailed medical examination before coming. This medical information was also entered into the computer one by one. They also had to submit proof of completion for the various immunizations required by the Executive Committee, done at their local disease control centers. The man in the white coat repeatedly reminded them: this was a matter of life and death, so they shouldn't hide anything. If they hadn't completed the requirements, they could get the shots here.
 
-　　最后医生给了每人两片白色的药片，要他们当场吃下去。
+Finally, the doctor gave each of them two white pills and told them to take them on the spot.
 
-　　“这是什么？”查梧础疑虑的看这药。
+"What's this?" Zha Wuchu asked, looking at the pills with suspicion.
 
-　　“驱虫药。”白大褂言简意赅的解释。
+"Deworming medicine," the man in the white coat explained succinctly.
 
-　　“我没虫。”大感屈辱的查梧础发出了抗议。
+"I don't have worms," Zha Wuchu protested, feeling greatly insulted.
 
-　　“吃吧，吃了没坏处。”白大褂不为所动，“你要去的是一个没有现代卫生设施的地方。”
+"Just take it. It won't do you any harm," the man in the white coat said, unmoved. "You are going to a place without modern sanitation facilities."
 
-　　吃完药，这几位又落到牙科室里。这次换了个年轻的小伙子，在每个人的嘴巴里又敲打了一阵。显然这几位的牙都不错，小牙医没拿出令人胆战心惊的转头之类的杀器。正当几个人都放下心来准备出去的时候，牙医撕下了三张预约单。
+After taking the medicine, the group found themselves in the dental office. This time, it was a young man who tapped around in each of their mouths. Apparently, their teeth were all in good condition, as the young dentist didn't bring out any terrifying instruments like drills. Just as they were all relaxing and preparing to leave, the dentist tore off three appointment slips.
 
-　　“后天下午三点过来清理牙结石。”
+"Come back the day after tomorrow at three in the afternoon for a dental cleaning."
 
-　　当他们怀着对牙医的恐怖再次回到登记处的时候，[萧子山][y001]已经在一台电脑后恭候他们了。手里拿着一堆金属的项链类的东西。
+When they returned to the registration office, still filled with terror of the dentist, [Xiao Zishan][y001] was already waiting for them behind a computer, holding a pile of metal necklace-like objects.
 
-　　“这是大家的身份牌。”[萧子山][y001]把这些链条分给他们，上面除了一个刻有名字和一个数字串号的金属片之外，还有个近似小U盘的东西，用一种不透明的东西密封着。
+"These are your ID tags," [Xiao Zishan][y001] said, distributing the chains. Besides a metal plate engraved with a name and a serial number, there was also a small, USB-drive-like object sealed in an opaque material.
 
-　　“狗牌。”有人说了。
+"Dog tags," someone said.
 
-　　“呵呵，对。不过是电子的。”[萧子山][y001]解释这狗牌的用处，金属身份牌没什么特殊的，小U盘一样的东西则是一个ID卡，通过感应，可以自动在服务器数据库里调阅出每个人的全部详细资料。当然，这个卡也能起到大学里的一卡通的作用。
+"Hehe, right. But electronic ones." [Xiao Zishan][y001] explained the use of the dog tags. The metal plate was nothing special, but the USB-like object was an ID card. Through induction, it could automatically pull up each person's full detailed profile from the server database. Of course, the card also functioned like a university all-in-one card.
 
-　　“那吃饭是不是凭这个卡就可以了？要充值吗？”
+"So we can use this card to eat? Do we need to charge it?"
 
-　　“不用充值，到食堂凭卡吃饭就可以，从现在起我们就是供给制了。”[萧子山][y001]一边示意他们坐下，“我说明一下，在基地里一切都是供给制的，你需要什么，都可以向执委会的后勤组提出申请，我们会发给的。但是要注意仅限生活用品。你要是想抽烟喝酒什么的，还是要花RMB的，这里有小卖部。”
+"No need to charge it. You can eat at the cafeteria with the card. From now on, we are on a supply system," [Xiao Zishan][y001] said, gesturing for them to sit down. "Let me explain. Everything at the base is on a supply system. If you need anything, you can apply to the Executive Committee's logistics group, and we will issue it to you. But please note that this is limited to daily necessities. If you want to smoke or drink, you still have to spend RMB. There is a small shop here."
 
-　　“上网呢？”查梧础看来很有网瘾。
+"What about internet access?" Zha Wuchu seemed to have a serious internet addiction.
 
-　　“同样是免费的。但是上网要凭ID卡登陆才行。”
+"That's also free. But you need to log in with your ID card to get online."
 
-　　“共产主义啊。”
+"This is communism."
 
-　　“距D日还有些日子，但是也就是最近的一二个月了。至于许多要点和规定，各位来之前，执委会都和你们说过。”
+"There are still some days until D-Day, but it will be within the next month or two. As for the many key points and regulations, the Executive Committee has already spoken with you all before you came."
 
-　　大家都点了下头。
+Everyone nodded.
 
-　　“最近尽量不要外出，外出一定要请假。后勤组已经把配发给你们的东西送到宿舍了。另外，大家带来的行李，计划协调组想察看一下，有些东西可能你们会忘记带，有些东西则要上缴给资源组统一使用。”[萧子山][y001]笑了一下，“当然，我们会按价折算，折算成股份还是点劵则按你们的要求。”
+"Please try not to go out much for the time being. If you must go out, you have to ask for leave. The logistics group has already delivered your allocated items to your dormitory. Also, the Planning and Coordination Group would like to inspect the luggage you brought. There might be some things you forgot to bring, and some things will need to be handed over to the resource group for unified use." [Xiao Zishan][y001] smiled. "Of course, we will compensate you at market value. Whether it's converted into shares or points will be up to you."
 
-　　“马上就要开全体大会了，大家先好好休息几天。最好到这里的网吧，用ID卡登陆看一下内部资料，里面有我们的计划概况和进度。再好好想想。如果想退出，全部东西和钱款都会退还给你们。”
+"There will be a general assembly soon. Everyone should rest well for a few days. It would be best to go to the internet cafe here, log in with your ID card, and review the internal documents. They contain our plan overview and progress. Think it over carefully. If you want to quit, all your belongings and money will be returned to you."
 
-　　“要是想退出就不来了。”有人说。
+"If we wanted to quit, we wouldn't have come," someone said.
 
-　　“没关系，再好好想想。毕竟是要从这世界彻底的消失，人非草木，总有个牵挂吧。想想能不能下这个决心。”
+"It's okay, think it over again. After all, you will be completely disappearing from this world. People are not plants; everyone has attachments. Think about whether you can really make this decision."
 
-　　基地的大会议室里，桌上开了桌牌，加上围观的，十来个人好不热闹。
+***
 
-　　[文德嗣][y002]看了一眼窗外：“有人注意我们了？”他甩下一张S。
+In the base's large conference room, name cards were set on the table. With the onlookers, the dozen or so people made for a lively scene.
 
-　　“没错，前天我去人武部打牌的时候，听人说的。”说话的是钟利时，一年多来他在本地交游广泛，“听人说，警察处打过电话来问过这事。”
+[Wen Desi][y002] glanced out the window. "Are we being watched?" He threw down a spade.
 
-　　“屁事，咱们这开公司又不犯法。”魏爱文把脚丫子也端到了椅子上。
+"That's right. I heard about it when I was playing cards at the People's Armed Forces Department the day before yesterday," said Zhong Lishi, who had made extensive local connections over the past year. "I heard the police department called to ask about this matter."
 
-　　[马千瞩][y005]慢条斯理的丢下一张牌：“看A片也不犯法，你到大街上看看去？”他皱了下眉，“你的脚又没洗吧？”
+"It's nothing. We're running a company, not breaking the law," Wei Aiwen said, propping his feet up on a chair.
 
-　　“那我们不也没在看A片嘛。”魏爱文大为不爽，这里的几个人，个个都是半含不露的味道，说话绕着弯子。
+[Ma Qianzhu][y005] slowly played a card. "Watching porn isn't illegal either, but would you do it on the street?" He frowned. "You haven't washed your feet again, have you?"
 
-　　“那叫组织聚众看A片，要赶80严打那会，你够枪毙的份。”[萧子山][y001]嘿嘿地笑着。
+"Well, we're not watching porn either," Wei Aiwen said, greatly displeased. Everyone here spoke in riddles, their words veiled and indirect.
 
-　　“你就瞎掰吧，看个A片就枪毙，你也领5美分？”魏爱文马上反驳起来。
+"That would be called 'organizing a group to watch pornography.' If this were the 'Strike Hard' campaign of the 80s, you'd be eligible for a firing squad," [Xiao Zishan][y001] chuckled.
 
-　　“这就是时间的伟大。”[萧子山][y001]说了句不着边际的话之后继续翻本子，“我觉得最近的确有点不对头，昨天车站来了个人，很可疑啊。”
+"You're just talking nonsense. Getting shot for watching porn? Are you also getting paid 50 cents a post?" Wei Aiwen immediately retorted.
 
-　　“难道就是传说中的国安处？”
+"That is the greatness of time," [Xiao Zishan][y001] said cryptically before returning to his notebook. "I feel like something has been off recently. There was a very suspicious person at the station yesterday."
 
-　　“这个说不好，”[萧子山][y001]顿了一下，其实他想回来的时候和大家说一声的，但是后来他忘记了，“也许只是偶然到来的，感觉是个专政机关的人……”
+"Could it be the legendary Ministry of State Security?"
 
-　　“你这就和没说一样。”魏爱文马上对其进行攻击。
+"It's hard to say," [Xiao Zishan][y001] paused. He had meant to tell everyone when he got back, but he had forgotten. "Maybe he was just a random visitor. I got the feeling he was from some organ of the dictatorship..."
 
-　　“嗯，”[萧子山][y001]承认，“但是我觉得他对‘穿越’这二个字特别有兴趣。”
+"That's the same as saying nothing," Wei Aiwen immediately attacked.
 
-　　屋子里的几个人沉默了一下，好像暴露了什么秘密一样。
+"Well," [Xiao Zishan][y001] admitted, "but I feel he was particularly interested in the word 'transmigration'."
 
-　　过了几分钟，[马千瞩][y005]对[文德嗣][y002]说：“[文总][y002]，我们的步子是不是更快一点？现在人来得差不多了。不来的也不会来了。”
+The room fell silent for a moment, as if a secret had been exposed.
 
-　　“还要怎么快？”[文德嗣][y002]慢吞吞的洗着牌，“船到现在还没着落！”
+After a few minutes, [Ma Qianzhu][y005] said to [Wen Desi][y002], "[Director Wen][y002], should we speed things up a bit? Most of the people are here now. Those who aren't coming won't be coming."
 
-　　“租不到？”
+"How much faster can we go?" [Wen Desi][y002] said slowly, shuffling the cards. "We still don't have a ship!"
 
-　　“我们这样成立才不过一年的新公司，谁肯租给我们？就算肯租，也和买艘新的差不多了。”
+"Can't we rent one?"
 
-　　“干脆买二手旧船吧。”
+"Who would rent to a new company like ours, established for less than a year? Even if they were willing, the cost would be almost the same as buying a new one."
 
-　　“这东西不是买二手车，到市场转一圈就成，里面的手续问题费老劲道了。[王洛宾][y003]这二个月天天都在跑这事。”
+"Let's just buy a second-hand one."
 
-　　“多花点钱开路吧，也别太挑剔了，贵就贵点。”钟利时提出建议，“反正RMB对我们很快就没用了。”
+"This isn't like buying a used car where you can just go to a market and look around. The paperwork is a huge hassle. [Wang Luobin][y003] has been running around dealing with this for the past two months."
 
-　　“那也得留点在手上备急用。”
+"Let's just spend more money to clear the way. Let's not be too picky. If it's expensive, it's expensive," Zhong Lishi suggested. "RMB will be useless to us soon anyway."
 
-　　“干脆备点金银好了，这东西紧急情况下拿出去，谁都认。”
+"We still need to keep some on hand for emergencies."
 
-　　“说到金银，咱们是不是应该带一批925工业银，最好直接造些西班牙比索带过去。不然一过去怎么和土著贸易？”
+"Let's just prepare some gold and silver. In an emergency, anyone will recognize that."
 
-　　“那时代不缺白银。带白银过去，第一成本就不合算，其次还要占吨位。贸易又不一定非要靠真金白银才能进行。易货好了。”[罗铎][y011]不以为然。
+"Speaking of gold and silver, should we bring a batch of 925 industrial silver? It would be best to directly mint some Spanish pesos to take with us. Otherwise, how will we trade with the natives when we get there?"
 
-　　“工业品生产是要有阶段的！”钟利时激动起来，“你觉得我们的工厂多久才能形成足够贸易的生产能力？起码三个月吧。你这三个月的补给和建设采购费用从哪里来？不要说去抢就好了！”
+"There was no shortage of silver in that era. Bringing silver with us would be, first, not cost-effective, and second, it would take up tonnage. Trade doesn't have to rely on real gold and silver. Bartering is fine," [Luo Duo][y011] said dismissively.
 
-　　“兄弟，你知道盐吗……”[罗铎][y011]慢吞吞地说道，“自古以来，食盐是一种全世界通用的货币。起码在我们要去的时代，向土著买东西还是很有购买力的。”
+"Industrial production has its stages!" Zhong Lishi became agitated. "How long do you think it will take for our factories to reach a production capacity sufficient for trade? At least three months, right? Where will you get the funds for supplies and construction during those three months? Don't just say we can go rob people!"
 
-　　钟利时平静了一点：“我们会晒盐吗？”
+"Brother, have you heard of salt..." [Luo Duo][y011] said slowly. "Since ancient times, salt has been a universal currency. At least in the era we are going to, it will still have considerable purchasing power for buying things from the natives."
 
-　　“不会，但是我们知道怎么晒盐。我手上有大把的资料。精盐、加碘盐、腌菜盐……”[罗铎][y011]意气风发地笑了笑，“我们在座的谁会炼钢？谁会做玻璃？谁会造步枪？我们拥有三千年文明积累的智慧，有着工业革命以来全部的现代科技——”他的手戏剧性的一挥，“我们，无所不能！”
+Zhong Lishi calmed down a bit. "Do we know how to make salt?"
 
-　　这句他自认为富有感染力的话就好像丢到了沼泽里一样，咕咚了一下就消失了。除了钟利时充满怀疑的一瞥之外，没激起任何的浪花。
+"No, but we know *how* to make salt. I have a ton of information on hand. Refined salt, iodized salt, pickling salt..." [Luo Duo][y011] smiled with gusto. "Who among us knows how to make steel? Who knows how to make glass? Who knows how to make a rifle? We possess the accumulated wisdom of three thousand years of civilization, and all the modern technology since the Industrial Revolution—" He made a dramatic wave of his hand. "We are omnipotent!"
 
-　　在接下来的几分钟里，[罗铎][y011]卖弄着他的制盐工艺，不时还和钟利时发生一点既不专业也不客观的争执。忽然[马千瞩][y005]叹了一口气：
+This statement, which he thought was full of infectious power, fell into the room like a stone into a swamp, making a small splash and then disappearing. Apart from a skeptical glance from Zhong Lishi, it failed to create any ripples.
 
-　　“俺们这里的讨论，怎么总是爱跑题呢？”
+For the next few minutes, [Luo Duo][y011] showed off his knowledge of salt production, occasionally getting into unprofessional and subjective arguments with Zhong Lishi. Suddenly, [Ma Qianzhu][y005] sighed.
 
-　　“习惯性跑题……”[文德嗣][y002]说，“好了，好了，我们的财政问题待会再说。[子山][y001]，人员报到情况怎么样了？”他象想起了什么，“你接回来的那四个人怎么样？”
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
-[y005]: /characters/y005 "马千瞩"
+"Why do our discussions here always go off-topic?"
+
+"Habitual digression..." [Wen Desi][y002] said. "Alright, alright, let's talk about our financial problems later. [Zishan][y001], what's the status of the personnel check-in?" He seemed to remember something. "How are those four people you brought back?"
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
+[y005]: /characters/y005 "Ma Qianzhu"
 [y011]: /characters/y011 "罗铎"
