--- a/_posts/2009-11-10-2-02400.md
+++ b/_posts/2009-11-10-2-02400.md
@@ -1,141 +1,141 @@
 ---
 layout: post
-title: 第二十四节 邬德的新任务（二）
+title: Section 24: Wu De's New Task (Part 2)
 category: 2
 path: 2009-11-10-2-02400.md
 tag: [normal]
 ---
 
-　　“这个，我觉得你还是继续从事生物工程这个对穿越大业更有帮助的工作为好。”
+"Well, I think you should continue to engage in bioengineering, which is more helpful to the great cause of transmigration."
 
-　　“不喜欢我的熏鱼实话说嘛。”胡仪成悻悻着，“算了，我刚解剖完一只兔子……”
+"Just say you don't like my smoked fish." Hu Yicheng said sullenly, "Forget it, I just dissected a rabbit..."
 
-　　“兔子？！”邬德一激凌，这可是好东西啊。
+"Rabbit?!" Wu De was startled. This was a good thing.
 
-　　“昨天打到的，”胡仪成笑得很象狐狸，“中午打算烤着吃。”
+"I caught it yesterday," Hu Yicheng smiled like a fox. "I plan to roast it for lunch."
 
-　　“中午？”邬德不无遗憾的想到那时候他还在工地上站岗放哨，肯定是没法吃烤兔肉了。
+"Lunch?" Wu De thought with regret that he would still be on guard duty at the construction site at that time, so he would definitely not be able to eat roasted rabbit meat.
 
-　　“不过我可以给你留个前腿……”
+"But I can save a foreleg for you..."
 
-　　邬德刚想道谢，忽然想起古话：无事献殷勤，非奸即盗。这个小胡和自己又不熟，干嘛请他吃兔肉？
+Wu De was about to thank him when he suddenly remembered the old saying: to be courteous for no reason is either treacherous or thievish. This Little Hu was not familiar with him, why would he treat him to rabbit meat?
 
-　　果然，胡仪成的狐狸尾巴马上就露了出来：“昨天，嗯，我看你做海鲜饭了，这个，我能不能来你这里搭伙啊？”
+Sure enough, Hu Yicheng's fox tail was immediately exposed: "Yesterday, um, I saw you making seafood rice. Well, can I join you for meals here?"
 
-　　“行啊，不过你得自己带米。”邬德很爽气的说，海鲜饭多做一点会更好吃。
+"Sure, but you have to bring your own rice." Wu De said readily. Seafood rice would be more delicious if more was made.
 
-　　“那可太好了，我也顺便学习学习。”他指着后厨的方向，“吴组长刚回来，一早上捞了十多筐鱼，正想办法加工呢。”
+"That's great, I can also learn by the way." He pointed to the direction of the back kitchen, "Team Leader Wu just came back. He caught more than ten baskets of fish this morning and is trying to figure out how to process them."
 
-　　“加工？那我可得去看看，别又给糟践了。”这个时空果然资源丰富。
+"Process them? Then I have to go and see, lest they be wasted again." This time and space was indeed rich in resources.
 
-　　“我带你去。”胡仪成大约对邬德的做饭本领很崇拜，一听他要来来指导做饭，当然是求之不得。
+"I'll take you there." Hu Yicheng probably admired Wu De's cooking skills very much. When he heard that he was coming to guide the cooking, he was of course overjoyed.
 
-　　后面里用树干当柱子，搭建起了一个帆布棚，里面热气腾腾的。一字搭开了一排大锅，烧火的，劈柴的，提水的，忙的不亦乐乎……里面赫然有几个女人！邬德想幸亏有先见之明，穿上条内裤，不然就成裸露癖了。
+In the back, a canvas shed was set up with tree trunks as pillars, and it was steamy inside. A row of large pots was set up, and people were busy lighting fires, chopping firewood, and carrying water... There were actually a few women inside! Wu De thought that fortunately he had the foresight to wear underwear, otherwise he would have become an exhibitionist.
 
-　　一进“厨房”，就见一个家伙拿了笔记本电脑埋头干活，小胡上前招呼一声：“[南海][y009]，有人要来给我们做鱼了！”
+As soon as he entered the "kitchen," he saw a guy working with his head buried in a laptop. Little Hu went up and greeted him, "[Nanhai][y009], someone is coming to cook fish for us!"
 
-　　[吴南海][y009]抬头看了看：“阿德啊？你个渔民最近怎么都不见你在船上？”上下又打量了一番，“几天不见，和个土人一样了。”
+[Wu Nanhai][y009] looked up, "Ah De? You fisherman, why haven't I seen you on the boat recently?" He looked him up and down again, "I haven't seen you for a few days, you look like a native."
 
-　　“我不是在当警戒哨嘛，过去是水兵，现在成海兵了。”他看了一眼自己，脱光了衣服人又精瘦，皮肤本来就黑，现在又赤膊赤脚，就穿个小裤衩……这形象可真够土的。
+"I'm on guard duty. I used to be a sailor, now I'm a marine." He looked at himself. He was naked, thin, and his skin was originally dark. Now he was shirtless and barefoot, wearing only a pair of small shorts... This image was really rustic.
 
-　　“[南海][y009]，你不是在农业组么？不搞蔬菜大棚，养鸡喂猪的，当起伙头军了？”
+"[Nanhai][y009], aren't you in the agriculture group? You're not building vegetable greenhouses, raising chickens and feeding pigs, but you've become a cook?"
 
-　　“[萧子山][y001]的主意，这小子为了摆脱管食堂的麻烦，硬说农业就是吃饭问题，说我来当伙食办主任是理所当然的。”[吴南海][y009]无奈的说，“其实我想去照料那些兔子和鸡，那些鸡大概水土不服，又受了惊吓，下了船就没下过蛋。也不知道什么时候才能恢复过来，还有那些猪，身体也不大好，不肯吃，让人担心那……”他说到那猪牛羊鸡鸭时的款款深情让邬德一阵寒颤。
+"It was [Xiao Zishan][y001]'s idea. That guy, in order to get rid of the trouble of managing the canteen, insisted that agriculture is a matter of eating, and said that it was natural for me to be the director of the food office." [Wu Nanhai][y009] said helplessly, "Actually, I want to take care of those rabbits and chickens. Those chickens are probably not used to the new environment and were frightened. They haven't laid any eggs since they got off the boat. I don't know when they will recover. And those pigs, they are not in good health either, they refuse to eat, which is worrying..." The deep affection he showed when he talked about the pigs, cattle, sheep, chickens, and ducks made Wu De shiver.
 
-　　“伙食办娘子军不少，你有福了……”
+"The food office has a lot of women, you're in luck..."
 
-　　“有啥福气？都是别人的老婆。”[吴南海][y009]毫无兴趣，“再说我对现代女人没兴趣，要养就从萝莉养起，说起来执委会该派人去广州买萝莉了吧？”
+"What luck? They are all other people's wives." [Wu Nanhai][y009] had no interest. "Besides, I'm not interested in modern women. If I want to raise one, I'll start from a loli. Speaking of which, the Executive Committee should send someone to Guangzhou to buy lolis, right?"
 
-　　正在深入探讨着萝莉几岁算是成熟和培养的方向到底是傲骄、无口、天然呆还是眼镜娘这些重大问题的时候，一个胖子怒气冲冲的来了，[吴南海][y009]一见面色大变，正要把脑袋埋得更深，却被那人一把揪了出来。
+While they were in-depth discussing major issues such as what age a loli is considered mature and whether the direction of cultivation should be tsundere, kuudere, natural-born moe, or meganekko, a fat man came in angrily. [Wu Nanhai][y009]'s face changed greatly. He was about to bury his head deeper, but was pulled out by that person.
 
-　　“我的‘蓝电’呢？”
+"Where is my 'Blue Lightning'?"
 
-　　[吴南海][y009]愁眉苦脸地说：“这个……你节哀吧……我们把它给埋了，你知道，这里天气热……”
+[Wu Nanhai][y009] said with a sad face, "Well... please accept my condolences... we buried it. You know, the weather here is hot..."
 
-　　来人脸色一征，居然双目噙泪，一甩头又出去了，突兀的让人目瞪口呆。
+The man's face was startled, and his eyes were actually filled with tears. He shook his head and went out again, leaving people dumbfounded.
 
-　　“这是谁啊？……”
+"Who is this?..."
 
-　　[吴南海][y009]说：“这是尼克察，从澳大利亚回来的。这次带了二匹赛马一些信鸽。”
+[Wu Nanhai][y009] said, "This is Nikcha, who came back from Australia. This time he brought two racehorses and some carrier pigeons."
 
-　　两匹退役的赛马“阿阑驰”和“蓝电”，都是原来澳洲马会注册过的，虽然马龄大了些。尼克察试图依靠自己在这方面一些见识，设想以后组建一只骑兵。但到这里之后，严酷的事实打消了他最初的设想。马是敏感的动物，登陆后的喧哗让“蓝电”受了惊，尽管用于固定的板架强行束服了它的躁动，它却执拗的反复把头撞到一侧的木梁上。好不容易等到人员物资上岸结束，马匹牲畜才被吊运上岸。营地里当然没有干净的马房，也找不到马草，草创的基地里连人喝得水都得从船上输送过来，马每天必须的清洁的温水也无法足量提供。
+The two retired racehorses, "Aranchi" and "Blue Lightning," were both originally registered with the Australian Jockey Club, although they were a bit old. Nikcha tried to rely on his knowledge in this area and envisioned forming a cavalry in the future. But after arriving here, the harsh reality shattered his initial vision. Horses are sensitive animals. The noise after landing frightened "Blue Lightning." Although the fixed board frame forcibly restrained its restlessness, it stubbornly and repeatedly hit its head against the wooden beam on one side. It was not easy to wait until the personnel and materials were ashore, and the horses and livestock were hoisted ashore. Of course, there was no clean stable in the camp, and no horse grass could be found. In the newly established base, even the water for people to drink had to be transported from the ship, and the clean warm water that the horses needed every day could not be provided in sufficient quantities.
 
-　　“他亲自跑到执委会去，反复那马有多珍贵，而且要求提供‘至少每天5人份’的豆、麦食品供应。”
+"He personally went to the Executive Committee, repeatedly emphasizing how precious the horse was, and demanded a supply of beans and wheat food of 'at least 5 people's portion per day'."
 
-　　“结果呢？”
+"And the result?"
 
-　　“还用说吗？船上哪来的大豆、黑豆和大麦啊？我也就只有一点种子。粮食是带了一些，但是为了节约空间带得是大米。”
+"Needless to say? Where on the ship could there be soybeans, black beans, and barley? I only have a few seeds. We did bring some grain, but in order to save space, we brought rice."
 
-　　“就被拒绝了？”
+"So he was rejected?"
 
-　　“正确的说是被婉拒了，因为[萧子山][y001]那个混蛋又把皮球踢到我这里来了！”[吴南海][y009]愤愤的说，“他非说我对动物最有爱心。我那是为了获取动物产品，不是爱心的问题。现在只要一涉及到活物的，统统都算在农业组头上。”
+"To be precise, he was politely rejected, because that bastard [Xiao Zishan][y001] kicked the ball to me again!" [Wu Nanhai][y009] said angrily, "He insisted that I have the most love for animals. I do that to obtain animal products, it's not a matter of love. Now, as long as it involves living things, it's all counted on the agriculture group."
 
-　　大概是为了证明他的话，后面用篱笆围起来的地方传来了狗叫的声音，一会此起彼伏，接着又夹杂着马嘶牛叫猪哼哼，鸡鸭也跟着凑起了热闹。一只脖子上戴着蝴蝶结的猫又钻了过来，往[吴南海][y009]的裤腿上直蹭。
+As if to prove his words, the sound of dogs barking came from the place enclosed by a fence behind. It was one after another, and then mixed with the neighing of horses, the lowing of cattle, and the grunting of pigs. Chickens and ducks also joined in the fun. A cat with a bow on its neck came over and rubbed against [Wu Nanhai][y009]'s trouser leg.
 
-　　“这是杨宝贵的狗。他带了五条，说是未来的军警用犬……”
+"This is Yang Baogui's dog. He brought five of them, saying they are future military and police dogs..."
 
-　　“那马呢？”邬德还是忘不了赛马的事情。
+"What about the horse?" Wu De still couldn't forget about the racehorse.
 
-　　“说来真不好意思，他是亲自把马和鸽子送过来的，还叮嘱我要照料好这些‘不会说话的朋友’。”[吴南海][y009]随手从一边的箩筐里捞了一条小鱼丢给小猫，“我没学过骡马饲养，也不知道怎么养才好。马又不肯吃东西——”
+"It's really embarrassing to say, he personally sent the horse and pigeons over, and also told me to take good care of these 'friends who can't speak'." [Wu Nanhai][y009] casually took a small fish from a basket on the side and threw it to the kitten. "I haven't learned how to raise mules and horses, and I don't know how to raise them well. The horse refuses to eat—"
 
-　　旁边的胡仪成点点头：“这马真够难伺候的，我们打来的草也不肯吃，就这么绝食。”
+Hu Yicheng next to him nodded, "This horse is really hard to serve. It won't eat the grass we cut, it's on a hunger strike."
 
-　　“对，好像还是狂躁不安。”[吴南海][y009]说，尼克察自己想尽一切办法也没能让马恢复平静，几天不吃东西加上天热加上蝇蚊，昨天它就倒下了。
+"Yes, it seems to be manic and restless," [Wu Nanhai][y009] said. Nikcha himself tried everything he could but failed to calm the horse down. After a few days of not eating, plus the hot weather and flies and mosquitoes, it collapsed yesterday.
 
-　　“昨晚我叫杨宝贵来看，他是兽医，说没治了，接着就挂了。我当时都没敢和老尼说……”
+"Last night I asked Yang Baogui to take a look. He is a veterinarian and said it was incurable, and then it died. I didn't dare to tell Old Ni at that time..."
 
-　　“那真有点可惜呢，赛马血统都很棒的。”
+"That's a real pity. Racehorses have great bloodlines."
 
-　　“其实也没什么可惜的，”胡仪成一脸不然的神情，“都是阉马，十八九岁的老阉马有什么用？”
+"Actually, it's not a pity," Hu Yicheng said with a look of disapproval. "They are all geldings. What's the use of an eighteen or nineteen-year-old old gelding?"
 
-　　“我也觉得没什么，”[吴南海][y009]也有点无所谓，“赛马干不了农活，拉不了车耕不了地的。不如挽马有用。”
+"I don't think it's a big deal either," [Wu Nanhai][y009] was also a little indifferent. "Racehorses can't do farm work, can't pull carts or plow the land. They are not as useful as draft horses."
 
-　　“对了，鱼呢？”
+"By the way, where are the fish?"
 
-　　“都在那边箩筐里呢。”[吴南海][y009]皱起了眉头“不知道做啥好了，每天清水煮鱼的……”
+"They are all in the baskets over there." [Wu Nanhai][y009] frowned. "I don't know what to do with them. We have boiled fish every day..."
 
-　　“明天就能有……”
+"Tomorrow we can have..."
 
-　　“嘘，你瞎掰什么？”[吴南海][y009]冲着棚子里的女人方向努努嘴，小声说着，“你想被唾沫淹死？我可告诉你，露馅了我可不知道啊。”
+"Shh, what are you talking about?" [Wu Nanhai][y009] nudged his mouth in the direction of the women in the shed and whispered, "Do you want to be drowned in saliva? I'm telling you, if the cat gets out of the bag, I don't know anything."
 
-　　“成，成。”
+"Okay, okay."
 
-　　“兔子肉？”
+"Rabbit meat?"
 
-　　“哎，你先帮忙动脑筋怎么处理这一堆鱼吧。”[吴南海][y009]把他拖到箩筐边，水淋淋的，有股大海的咸腥味，让邬德觉得很熟悉。
+"Hey, you first help me figure out how to deal with this pile of fish." [Wu Nanhai][y009] dragged him to the side of the basket. It was dripping with water and had a salty and fishy smell of the sea, which made Wu De feel very familiar.
 
-　　箩筐里什么鱼都有，大大小小的，连小号的鲨鱼都有。这东西阿摩尼亚味道太浓，不处理是没法吃的。
+There were all kinds of fish in the basket, large and small, and even small sharks. This thing had a strong ammonia smell and was inedible without treatment.
 
-　　“清水煮要作为海鲜品尝来说是最好的办法，原汁原味，但是现在要拿鱼作为日常的蛋白质补充，这种做法就太寡淡了。我的办法也没什么稀罕的，就是做海鲜饭或者烧烤。”
+"Boiling in plain water is the best way to enjoy seafood, to taste its original flavor. But now that we are using fish as a daily protein supplement, this method is too bland. My method is nothing special, it's just making seafood rice or barbecue."
 
-　　“烤鱼？我们没香料……”
+"Grilled fish? We don't have spices..."
 
-　　“没有香料也可以做的，海鲜饭更简单。”他看了看手表，快10点了，自己要到12点上哨，正好吃了饭再去。“我来演示一下。”
+"You can do it without spices. Seafood rice is even simpler." He looked at his watch. It was almost 10 o'clock. He had to be on guard at 12 o'clock, so he could eat before he went. "I'll demonstrate."
 
-　　“那野战炊具饭锅最多可以做几人份的饭？”
+"How many people's rice can the field cooker make at most?"
 
-　　“按每人4两米算是一百人份的。”
+"It's for a hundred people, based on 4 liang of rice per person."
 
-　　“行，我就先做一锅，然后你们再做好了。”
+"Okay, I'll make a pot first, and then you guys can make more."
 
-　　[吴南海][y009]见有人愿意主动请缨，赶紧把伙食办的人都召集起来听候调遣。
+Seeing that someone was willing to volunteer, [Wu Nanhai][y009] quickly gathered all the people from the food office to be at his disposal.
 
-　　邬德一面吩咐大家把鱼都收拾好，按大小和品种分开，红肉鱼和白肉鱼要分开，油脂多的要和少的分开，大小也分门别类的进行分级。
+Wu De instructed everyone to clean the fish and separate them according to size and species. Red-fleshed fish and white-fleshed fish should be separated, oily fish should be separated from lean fish, and they should also be graded by size.
 
-　　“海鱼的种类很多，我们利用的方式也不同，鱼获到了岸上，就要及时把它们分类，这样才便于处理。”
+"There are many kinds of sea fish, and we use them in different ways. When the fish are brought ashore, they should be sorted in time so that they can be easily processed."
 
-　　邬德说完又带人到河边去采野菜，他昨天晚上就在附近采到了不少：有车前草、苦菜、野葱和野紫苏，采上两捆在水里洗干净了拿根茅草扎了，一并带了回来。
+After Wu De finished speaking, he led people to the river to collect wild vegetables. He had collected a lot nearby last night: plantain, sow thistle, wild onion, and wild perilla. He collected two bundles, washed them in the water, tied them with a thatch, and brought them back together.
 
-　　炉灶里投进了大量柴草，又有专人鼓风，很快就把火烧大了，水开下米。乘着煮饭的功夫，他带头收拾起鱼来，作为示范。
+A large amount of firewood was thrown into the stove, and someone was specially assigned to blow the bellows. The fire soon grew large, and the water boiled and the rice was added. While the rice was cooking, he took the lead in cleaning the fish as a demonstration.
 
-　　鱼头鱼尾鱼肚子这些下水都放在一边，鱼身剁成小块，贝壳都撬开把肉拿出，海带野菜都剁碎。两把火工夫，米就涨开了，汤汤水水成粥了，把鱼肉贝肉海带都扔进锅，拿大马勺把米和鱼搅匀，焖上几分钟，再扔野菜和野葱，焖一分钟，撒上点盐，一锅海鲜饭就成了。
+The fish heads, tails, and guts were set aside. The fish body was chopped into small pieces, the shells were pried open and the meat was taken out, and the kelp and wild vegetables were chopped up. After two fires, the rice had expanded and turned into a soupy porridge. He threw the fish meat, shellfish meat, and kelp into the pot, stirred the rice and fish evenly with a large ladle, simmered for a few minutes, then threw in the wild vegetables and wild onions, simmered for another minute, sprinkled some salt, and a pot of seafood rice was ready.
 
-　　收拾下来的鱼下水，加上没什么价值的小杂鱼，可以用来发酵做鱼露，伙食办没有水泥池子，不过从巡检司的伙房里找到了几口大水缸，邬德就指导他们做起鱼露来了。
+The fish offal that was cleaned up, plus some small miscellaneous fish of little value, could be used to ferment and make fish sauce. The food office did not have a cement pool, but they found a few large water vats in the kitchen of the inspection department, so Wu De guided them to make fish sauce.
 
-　　理论上说做鱼露什么鱼都可以，但是一般只用没有经济价值的小型杂鱼。加工中产生的部分鱼下水也可以使用，加入鱼重量大约1/3比例的盐，拌匀之后上面加竹篾的盖子，再压上大石头就可以了，发酵的时候外面的气温最好是30摄氏度以上。邬德要他们把缸放在室外，这样有利于发酵。
+Theoretically, any fish can be used to make fish sauce, but generally only small miscellaneous fish with no economic value are used. Some of the fish offal produced during processing can also be used. Add salt in a proportion of about 1/3 of the weight of the fish, mix it evenly, cover it with a bamboo mat, and then press it with a large stone. The outside temperature during fermentation is best to be above 30 degrees Celsius. Wu De asked them to put the vats outdoors to facilitate fermentation.
 
-　　“要一年时间才能好，”邬德说，“不过味道非常鲜美……”
+"It will take a year to be ready," Wu De said, "but the taste is very delicious..."
 
-　　又教大家怎么腌鱼晒鱼，一时间厨房后面臭气熏天，腥味扑鼻，苍蝇逐臭而来，大家都有点顶不住了。有个女生实在顶不住了，跑外面吐了起来——今天中午的海鲜饭，她是无福享受了。
-[y001]: /characters/y001 "萧子山"
-[y009]: /characters/y009 "吴南海"
+He also taught everyone how to salt and dry fish. For a time, the back of the kitchen was filled with a foul smell and a fishy smell. Flies were attracted by the smell, and everyone could barely stand it. A girl really couldn't stand it and ran outside to vomit—she would not be able to enjoy the seafood rice for lunch today.
+[y001]: /characters/y001 "Xiao Zishan"
+[y009]: /characters/y009 "Wu Nanhai"
