--- a/_posts/2009-11-13-2-02700.md
+++ b/_posts/2009-11-13-2-02700.md
@@ -1,78 +1,78 @@
 ---
 layout: post
-title: 第二十七节 百仞城
+title: Section 27: Bairen City
 category: 2
 path: 2009-11-13-2-02700.md
 tag: [normal]
 ---
 
-　　在以后的几天里，符有地迅速完成了从一个老实巴交的农民彻底蜕变成小恶霸的过程。在他朴素的农民意识看来，经手三分肥是天经地义的事情。
+In the following days, Fu Youdi quickly completed the process of completely transforming from an honest farmer into a petty tyrant. In his simple peasant consciousness, it was only natural to take a cut of whatever passed through his hands.
 
-　　开始还只是分饭的时候多给自己捞点干得，荤得。接着带工分配活计的任务也交给了他，邬德只每天告诉他们要干多少活，怎么干并不过问。于是他就把活都分给其他四个人干，自己就做个样子，开始有人不情愿，也跟着磨洋工，符有地还不敢管，但是到了吃饭的时候伙食权的威力就体现出来了——不肯干的符有地就尽舀面上的汤给人家。王田因为和他一样是本地土著，两个人比较说得来，成了优待的对象，活少干吃得多，另外三个人就成了受害者，干得多吃得少，于是在某天晚饭的时候爆发了一次小小的冲突。林兴带头反抗，把符有地打了个嘴啃泥。邬德并不干涉里面的是非曲直，而是把参与殴斗的每个人都抽了五十藤条，林兴第一个动手，打一百。
+At first, it was just taking more of the dry and meaty parts for himself when distributing food. Then, the task of assigning work was also given to him. Wu De only told them how much work to do each day, and did not ask how it was done. So he assigned all the work to the other four people, and just pretended to work himself. At first, some people were unwilling and also slacked off. Fu Youdi did not dare to manage them, but at mealtime, the power of food distribution was revealed—Fu Youdi would only give the soup on the surface to those who were unwilling to work. Wang Tian, because he was a local native like him, the two of them got along better and became the object of preferential treatment, working less and eating more. The other three people became the victims, working more and eating less. So one evening at dinner, a small conflict broke out. Lin Xing took the lead in resisting and knocked Fu Youdi to the ground. Wu De did not interfere with the rights and wrongs of the matter, but gave each person involved in the fight fifty lashes with a rattan cane. Lin Xing, who started the fight, received one hundred.
 
-　　毫无疑问，当天这五个俘虏的屁股在火烧火燎的时候，他们彼此间的仇恨也熊熊燃烧了。符有地完全拉破了脸皮，他开始敢于对着林兴吼叫，克扣粮食也变得肆无忌惮。矛盾越来越深——根据邬德的观察五个人分成了三派：符有地拉拢着王田，林兴企图反抗，他们都企图拉拢在中间打酱油的两个人。邬德有时候又故意在其中制造矛盾，有时候说干活不力，有时候则借口清洁工作没做好，降低伙食标准。当某个人的错误造成所有人都要饿饭的时候，互相指责更加深了他们之间的矛盾。
+Undoubtedly, on that day, while the buttocks of the five captives were burning, their hatred for each other was also burning fiercely. Fu Youdi completely lost face. He began to dare to shout at Lin Xing, and his deduction of food became unscrupulous. The conflict deepened—according to Wu De's observation, the five people were divided into three factions: Fu Youdi was trying to win over Wang Tian, Lin Xing was trying to resist, and they were all trying to win over the two people who were on the sidelines. Wu De sometimes deliberately created conflicts among them, sometimes saying that they were not working hard enough, and sometimes using the excuse that the cleaning work was not done well to lower the food standard. When one person's mistake caused everyone to go hungry, mutual accusations further deepened the conflict between them.
 
-　　比较聪明也大胆一些的林兴壮着胆子直接朝他抱怨符有地的问题，虽然他的普通话说得结结巴巴，有时候还词不达意。于是邬德借机收拾了一顿开始发胖的符有地——让他知道点分寸；还有意无意的表现出袒护林兴的样子。被符有地剥削的苦不堪言的俘虏对邬德的明察秋毫感激不尽，而且也知道了是林兴去打了小报告才会这样，于是连最懒惰的人也开始积极的学起普通话来。
+The smarter and bolder Lin Xing plucked up the courage to complain directly to him about Fu Youdi's problem, although his Mandarin was halting and sometimes he couldn't express himself clearly. So Wu De took the opportunity to teach the fattening Fu Youdi a lesson—to let him know his limits; he also intentionally or unintentionally showed his favorit-ism towards Lin Xing. The captives, who were suffering from Fu Youdi's exploitation, were grateful for Wu De's insight, and they also knew that it was because Lin Xing had reported him. So even the laziest people began to actively learn Mandarin.
 
-　　“阿德你真行！给他们都吃了迷魂药？”熊卜佑发现自己的学生忽然变得勤奋起来，晚上吃完饭之后也不急着睡觉了，而是来找他补课学说话。
+"Ah De, you're really something! Did you give them a love potion?" Xiong Buyou found that his students had suddenly become diligent. After dinner, they were not in a hurry to go to bed, but came to him for extra lessons to learn to speak.
 
-　　邬德嘿嘿笑着，这个局面一点都不出他的意外。在人性方面17世纪和21世纪并没有什么本质的不同。
+Wu De chuckled. This situation was not at all unexpected to him. In terms of human nature, there was no essential difference between the 17th century and the 21st century.
 
-　　邬德的新任务只是日常工作中的一段小小的插曲而已，虽然这件事情在后世看来意义重大，在当时却很少有人在意。所有的注意力都围绕着筑路工程的进度。
+Wu De's new task was just a small episode in his daily work. Although this matter was of great significance in later generations, few people paid attention to it at the time. All the attention was focused on the progress of the road construction project.
 
-　　除了少量平整和修形使用人力之外，全线采用机械化施工。建筑组对如何组织施工也越来越轻车熟路，到D+6，也就是大明崇祯元年农历九月初七，公历1628年十月三日这天，全长12公里的博铺到百仞滩简易公路比执委会要求晚一天全线贯通——从百仞滩到博铺虽然都是一马平川，实际上还是略有坡度的，公路并不是一条直线，而是略呈曲线形。
+Except for a small amount of leveling and shaping using manpower, the entire line was constructed with mechanization. The construction team became more and more familiar with how to organize the construction. By D+6, which was the seventh day of the ninth lunar month of the first year of the Chongzhen reign of the Ming Dynasty, or October 3, 1628 in the Gregorian calendar, the 12-kilometer-long simple highway from Bopu to Bairen Tan was completed one day later than the Executive Committee's request—although it was a flat plain from Bairen Tan to Bopu, there was actually a slight slope. The highway was not a straight line, but slightly curved.
 
-　　公路沿线的设防工事继续保留着，未来它们会被扩展加固成小型的要塞，作为护路的基石。
+The fortifications along the highway were kept. In the future, they would be expanded and reinforced into small fortresses as the cornerstone of road protection.
 
-　　至于百仞滩本身，它将成为穿越众在这个时空的第一个城市。
+As for Bairen Tan itself, it would become the first city of the transmigrators in this time and space.
 
-　　建筑组已经给这个新的城市取了一个简单又贴切的名字：“百仞城”。
+The construction team had already given this new city a simple and fitting name: "Bairen City."
 
-　　“有点武侠小说的味道啊。”梅晚意气风发地站在百仞滩的悬崖边，这里就是21世纪的百仞滩水电站滚水坝的位置，与发电房的落差大约有16米，文澜河在这里有一个剧烈的转弯，九级岩石形成了百仞滩的斜坡瀑布，水流湍急，声如雷吼，这就是所谓的“百仞滩声”了，方圆二十多里都能听到。
+"It has a bit of a wuxia novel feel to it." Mei Wan stood on the cliff of Bairen Tan with high spirits. This was the location of the Bairen Tan hydropower station's spillway in the 21st century. The drop to the power house was about 16 meters. The Wenlan River had a sharp turn here. The nine-level rocks formed the slope waterfall of Bairen Tan. The water flow was rapid, and the sound was like thunder. This was the so-called "Bairen Tan sound," which could be heard for more than twenty li around.
 
-　　“百仞城主！”燕雀志挥着手里的标杆，摆出一个pose。几个人也跟着比划了几下拳脚。
+"Lord of Bairen City!" Yan Quezhi waved the survey pole in his hand and struck a pose. A few people also followed suit and made a few martial arts moves.
 
-　　“规划图出了没有？”
+"Is the plan out yet?"
 
-　　“出了。”[李潇侣][y156]拉开一张1：1000的规划地图。对这个所谓“传承着21世纪的文明火种的基地”该如何规划，从建筑组本身到执委会的各部门都提出了自己的看法和建议，[李潇侣][y156]归纳下来，决定按照70年代末期的社会主义新农村的规划思路进行设计，当时有一种专门的规划设计图是专门针对“公社驻地”这一级别的村镇的，这种村镇即考虑到了行政、教育、小工业企业，也考虑到了农业生产性建筑，是一种城乡结合，工农副兼顾的新型农村居民模式。
+"It's out." [Li Xiaolü][y156] unfolded a 1:1000 planning map. As for how to plan this so-called "base that inherits the flame of civilization of the 21st century," from the construction team itself to the various departments of the Executive Committee, everyone put forward their own views and suggestions. [Li Xiaolü][y156] summarized them and decided to design it according to the planning ideas of the new socialist countryside in the late 1970s. At that time, there was a special planning and design drawing specifically for the "commune seat" level of villages and towns. This kind of village and town considered administration, education, small industrial enterprises, and also agricultural production buildings. It was a new type of rural residential model that combined urban and rural areas, and took into account industry, agriculture, and sideline businesses.
 
-　　百仞城的规划是整个城市沿文澜河两岸展开，其中主城区和水电区设置文澜河东岸，重工业区在西岸。
+The plan for Bairen City was for the entire city to be developed along both banks of the Wenlan River, with the main urban area and the hydropower area on the east bank of the Wenlan River, and the heavy industrial area on the west bank.
 
-　　水电区将建造电站、水处理厂，未来还将设置一个小型的内河码头和仓库。
+The hydropower area will build a power station, a water treatment plant, and in the future, a small inland river wharf and warehouse will be set up.
 
-　　主城距离河岸边的水电区大约100米。这一地块的地下水位要低一些，土壤承载力也很好，整个地面自南向北有大约4％的坡度，凭借自然坡度就可以有效的排泄雨水。
+The main city is about 100 meters away from the hydropower area on the river bank. The groundwater level of this plot is lower, and the soil bearing capacity is also very good. The entire ground has a slope of about 4% from south to north, and rainwater can be effectively discharged by relying on the natural slope.
 
-　　在主城区最南面是供水站，因为有坡度的关系，自来水无需加压，使用简单的水塔就可以实现自全城供水。
+At the southernmost end of the main urban area is the water supply station. Because of the slope, the tap water does not need to be pressurized, and a simple water tower can be used to supply water to the entire city.
 
-　　主城区根据用途不同，规划出以下区域：
+The main urban area is planned into the following areas according to different uses:
 
-　　行政区，在主城区的中间地段，沿着南北向主干道依次安排各个政府机构，
+Administrative area, in the middle section of the main urban area, various government agencies are arranged in order along the north-south main road.
 
-　　文教卫区，在行政区的东面，计划将有学校、卫生所、图书馆、简易的体育场和俱乐部。
+Cultural, educational, and health area, to the east of the administrative area, it is planned to have schools, health clinics, libraries, simple stadiums, and clubs.
 
-　　居住区，位于主城区的东北区域，占地面积最大——简易房宿舍不需要占用这么大的面积，但是考虑将来500多人都要组织自己的家庭，而且家庭规模可能会很大，所以先把房基地留足。
+Residential area, located in the northeast area of the main urban area, with the largest area—the simple dormitories do not need to occupy such a large area, but considering that more than 500 people will organize their own families in the future, and the family size may be very large, so the housing land is reserved first.
 
-　　工业品仓储区，存储包括所有从21世纪时空运来的物资、设备、机器，也包括军火。这个区域将有单独的围墙。
+Industrial product storage area, storing all materials, equipment, and machines transported from the 21st century, including arms. This area will have a separate wall.
 
-　　农业区，包括农产品加工厂、粮仓、兽医站、蔬菜大棚、牲畜圈，另外有沼气池一座。
+Agricultural area, including agricultural product processing plants, granaries, veterinary stations, vegetable greenhouses, and livestock pens, as well as a biogas digester.
 
-　　工业区，各种机械、零件制造和装备工厂。
+Industrial area, various machinery, parts manufacturing, and equipment factories.
 
-　　主城区完全按照功能进行规划区域，居住区与工业区分开，最大程度的考虑了舒适度和安全性。
+The main urban area is completely planned according to function. The residential area is separated from the industrial area, and comfort and safety are considered to the greatest extent.
 
-　　重工业区由于污染较大，再考虑到临高以东北风向为主，所以重工业区设置在下风区的文澜河西岸，包括规划中的钢铁厂、化工厂和那些污染较为严重的工业，如造纸厂。
+Due to the heavy pollution of the heavy industrial area, and considering that the prevailing wind in Lingao is from the northeast, the heavy industrial area is located on the west bank of the Wenlan River in the downwind area, including the planned steel plant, chemical plant, and those industries with more serious pollution, such as paper mills.
 
-　　在主城区的东门外还将设立一个开放式的商业贸易区，用于与当地土著交换农产品、土特产和小商品。
+An open commercial and trade area will also be set up outside the east gate of the main urban area for exchanging agricultural products, local specialties, and small commodities with the local natives.
 
-　　宏伟的百仞城规划图获得了执委会的一致同意，几乎同时，某些人就开始争夺未来的“长安街”上自己的部门的位置了，到底谁的部委大楼能离执委会大厦更近一些差点引起一些热心成员拳脚相向，直到[文德嗣][y002]反复说明眼下的规划里根本没有什么各部委大楼，也不存执委会大厦之类的东西，规划里只有一个行政机构的地基标注而已。不用说几年之内大家都是要合署办公的。
+The grand plan for Bairen City was unanimously approved by the Executive Committee. Almost at the same time, some people began to compete for the position of their own department on the future "Chang'an Avenue." The question of whose ministry building could be closer to the Executive Committee building almost caused some enthusiastic members to come to blows, until [Wen Desi][y002] repeatedly explained that there were no ministry buildings in the current plan, nor was there an Executive Committee building. There was only a foundation marker for an administrative agency in the plan. Needless to say, everyone would be working together in the same office for several years.
 
-　　要展开建设，象海滩上那样用船上的辅机来供电已经不现实了。执委会有多个选择，包括柴油发电机组、风力发电机组和太阳能发电站，但是这些东西各有利弊，内陆地区风力有限，风力发电机的功率不过300瓦，除了照明之外几乎没什么用，太阳能的发电量也很有限，出于节约柴油的考虑，柴油发电机只作为应急使用。
+To start construction, it was no longer realistic to use the auxiliary engines on the ship for power supply as on the beach. The Executive Committee had multiple choices, including diesel generator sets, wind turbine generator sets, and solar power stations. However, these things had their own advantages and disadvantages. The wind power in the inland area was limited, and the power of the wind turbines was only 300 watts, which was almost useless except for lighting. The power generation of solar energy was also very limited. For the sake of saving diesel, diesel generators were only used for emergencies.
 
-　　拖拉机从海滩基地上用拖车运来了一台怪模怪样的东西：黑色的铸铁质地，有着烟囱和飞轮，裸露的管道、各种阀门、压力表……看起来很蒸汽很朋克。大家都好奇的围拢上来
+A tractor transported a strange-looking thing from the beach base on a trailer: it was made of black cast iron, with a chimney and a flywheel, exposed pipes, various valves, and pressure gauges... it looked very steampunk. Everyone gathered around curiously.
 
-　　“锅驼机。”[马千瞩][y005]简单明了地回答了大家的疑问，这个东西就是用锅炉驮带蒸汽机的动力机械，它的结构简单，操作方便、维护容易，既能移动又能固定。使用效率高，运行可靠性好，能长时间连续工作。用途又特别广泛，从排涝、灌溉、碾米、磨粉、榨油乃至带动发电机发电或者直接作为各种工业机械的动力均可，从这点来说它很象现代农村的单缸柴油发动机。相比之下，它的劣势是比柴油机笨重得多，但是对穿越者来说笨重不是问题，关键是锅炉很不挑食，从木材、柴草、劣质煤炭什么燃料都能使用，能节约宝贵的柴油。
+"A portable steam engine," [Ma Qianzhu][y005] answered everyone's questions simply and clearly. This thing was a power machine that used a boiler to carry a steam engine. Its structure was simple, easy to operate, and easy to maintain. It could be both mobile and fixed. It had high efficiency, good operational reliability, and could work continuously for a long time. Its uses were also particularly wide, from drainage, irrigation, rice milling, flour milling, oil pressing, to driving a generator to generate electricity or directly as the power for various industrial machinery. In this respect, it was very similar to the single-cylinder diesel engine in modern rural areas. In contrast, its disadvantage was that it was much heavier than a diesel engine, but weight was not a problem for the transmigrators. The key was that the boiler was not picky about food. It could use any fuel from wood, firewood, and low-quality coal, which could save precious diesel.
 
-　　目前锅驼机即使在柴油机十分普及的情况下依然有一定的市场。执委会一共采购了6台锅驼机，其中2台是捷克产的单胆火管卧式复胀凝气式锅驼机，飞轮速度达1000转/分，最大功率290马力（213.15KW），用来带动发电机每小时可发电200度以上。这种锅驼机是固定式的，必需在平整的地面上才能工作，另外4台则是100马力的移动式机组，可以用汽车、拖拉机甚至马匹来进行牵引。
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
-[y156]: /characters/y156 "李潇侣"
+At present, portable steam engines still have a certain market even when diesel engines are very popular. The Executive Committee purchased a total of 6 portable steam engines, of which 2 were Czech-made single-furnace fire-tube horizontal compound condensing portable steam engines, with a flywheel speed of 1000 rpm and a maximum power of 290 horsepower (213.15KW). They were used to drive a generator to generate more than 200 kWh of electricity per hour. This kind of portable steam engine was fixed and had to work on a flat ground. The other 4 were 100-horsepower mobile units, which could be towed by cars, tractors, or even horses.
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma Qianzhu"
+[y156]: /characters/y156 "Li Xiaolü"
