--- a/_posts/2009-11-14-2-02800.md
+++ b/_posts/2009-11-14-2-02800.md
@@ -1,60 +1,60 @@
 ---
 layout: post
-title: 第二十八节 水与电（一）
+title: Section 28: Water and Electricity (Part 1)
 category: 2
 path: 2009-11-14-2-02800.md
 tag: [normal]
 ---
 
-　　这台用来发电的锅驼机原先打算安装在主城区，但它的污染严重，烟灰乱飞，噪音很大，加上锅炉需要大量的水，所以最后还是安装在水电区。为了防洪，水电区的火力电站、配电房、变电所所在的地基被专门垫高了。
+This portable steam engine used for power generation was originally intended to be installed in the main urban area, but its pollution was serious, with soot flying everywhere and loud noise. In addition, the boiler required a large amount of water, so it was finally installed in the hydropower area. For flood control, the foundations of the thermal power station, power distribution room, and substation in the hydropower area were specially raised.
 
-　　锅驼机虽然对穿越众来说有许多好处，但它每天需要的燃料也很可观，更不用说锅炉是需要用软水的，从船上给机器运蒸馏水未免太奢侈。如果使用天然水以雨水为最佳，河水也可以凑合，但是最好经过软化处理，[罗铎][y011]说他可以做栲胶来进行水质软化，不过一时间没地方给他找原料。最后[王洛宾][y003]根据在农村的经验，说可以用烧过的开水代用。
+Although the portable steam engine had many benefits for the transmigrators, the fuel it required every day was also considerable. Not to mention that the boiler needed soft water, and it was too extravagant to transport distilled water from the ship for the machine. If natural water was used, rainwater was the best, and river water could also be used, but it was best to soften it. [Luo Duo][y011] said he could make tannin to soften the water, but he couldn't find the raw materials for a while. Finally, [Wang Luobin][y003], based on his experience in the countryside, said that boiled water could be used as a substitute.
 
-　　给这个庞然大物烧开水，未免有点滑稽，河滩上一字排挖了好多炉灶，把船上带的锅子都卸了下来烧水，火苗熊熊，蒸汽弥漫，一时间无比的壮观。穿越众们又投入到割草伐木的工作中去，各种柴火堆得象小山一样。
+Boiling water for this behemoth was a bit ridiculous. A row of stoves was dug on the river beach, and all the pots from the ship were unloaded to boil water. The flames were blazing and steam was everywhere. It was a magnificent sight for a while. The transmigrators were once again engaged in the work of cutting grass and felling trees, and all kinds of firewood were piled up like small mountains.
 
-　　“为什么不用柴油发电机？”[文德嗣][y002]看到这样壮观的场面豪无激动之情，在他看来这简直就是浪费时间和人力，锅驼机可以不用油是不假，但这样耗费下来的人力也根本谈不上经济。
+"Why not use a diesel generator?" [Wen Desi][y002] saw this magnificent scene without any excitement. In his opinion, this was simply a waste of time and manpower. It was true that the portable steam engine could be used without oil, but the manpower consumed in this way was not economical at all.
 
-　　大马力锅驼机运转需要硬化的地面——不仅是锅驼机的地基，整个城区都要进行地面硬化工作，特别是即将建设的简易房住宅区和城区的街道。
+The operation of a high-power portable steam engine required a hardened ground—not only the foundation of the portable steam engine, but the entire urban area had to be hardened, especially the upcoming simple housing residential area and the streets of the urban area.
 
-　　穿越众手里还没有砖，但是做混凝土却很方便，水泥和钢筋是随船运来的，石头在百仞滩要多少有多少——百仞滩在历史上一直是临高的采石场，石头不仅供应县内使用，还销售到临近各县。穿越众到来后石匠们都跑了，他们采下来打磨的石件有许多留存着，采石场里还有大量开采后剩下的碎石废料——河滩上有的是河沙，筛过就可以使用。从博铺运来了水泥和搅拌机，做混凝土还需要木模板。吴旷明在博铺建立起一个电力锯木厂，可以方便的开出各种尺寸的木料，很快就把木模板做好运来了。
+The transmigrators did not have bricks in their hands, but it was very convenient to make concrete. Cement and steel bars were transported with the ship, and there were as many stones as they wanted at Bairen Tan—Bairen Tan had always been Lingao's quarry in history. The stones not only supplied the county, but were also sold to neighboring counties. After the transmigrators arrived, the stonemasons all ran away. Many of the stone pieces they had quarried and polished were left behind. There was also a large amount of crushed stone waste left over from quarrying in the quarry—there was plenty of river sand on the river beach, which could be used after being sieved. Cement and mixers were transported from Bopu, and wooden formwork was also needed to make concrete. Wu Kuangming set up an electric sawmill in Bopu, which could conveniently cut wood of various sizes, and soon the wooden formwork was made and transported.
 
-　　完成了锅驼机电站的地面硬化之后，建筑组干脆一鼓作气的把水电项目也开工了，毕竟这样每天烧水喂锅炉不是个事。而且随着执委会的办公部门、住宅区的搬迁和新的工业区建立，用电量马上就会大增。到时候这点电量就不够了。
+After completing the ground hardening of the portable steam engine power station, the construction team simply started the hydropower project in one go. After all, boiling water to feed the boiler every day was not a long-term solution. And with the relocation of the Executive Committee's office departments, residential areas, and the establishment of new industrial areas, the electricity consumption would increase sharply. At that time, this amount of electricity would not be enough.
 
-　　能源组在能源规划中把百仞滩水电站作为其重点工程，手头准备了电站的全套设计图纸，但是他们与建筑组开会协商之后大家一致认为完全按这个方案施工目前力有未逮。
+The energy group regarded the Bairen Tan hydropower station as its key project in its energy planning and had a full set of design drawings for the power station on hand. However, after a meeting and consultation with the construction team, everyone agreed that it was currently beyond their capabilities to construct it completely according to this plan.
 
-　　1967年春节过后开工到1968年底建成的百仞滩水电站，拦河坝长94米，高7.5米，还有配套的闸门.、函洞、渠道、渡槽、水管……即使在20世纪的临高也是倾全县之力才完成的大工程，从发动机关干部300多人，水电工程人员100多人开始，到全县征调民工几百人，还特意从头咀、黄龙、昆社三个公社调集能挑重担的渔家妇女200多人挑运大石。仅投入劳动力达到6.4万个工日，完成土方5.18万立方米，砌石5110立方米，浇注混凝土630立方米……
+The Bairen Tan hydropower station, which started construction after the Spring Festival in 1967 and was completed by the end of 1968, had a dam 94 meters long and 7.5 meters high, as well as supporting gates, culverts, channels, aqueducts, and water pipes... Even in 20th-century Lingao, it was a major project completed with the efforts of the entire county. It started with more than 300 cadres from government agencies and more than 100 hydropower engineering personnel, and then mobilized hundreds of civilian laborers from the whole county. They even specially transferred more than 200 fishermen's wives who could carry heavy loads from the three communes of Touzui, Huanglong, and Kunshe to carry large stones. The labor input alone reached 64,000 man-days, completing 51,800 cubic meters of earthwork, 5,110 cubic meters of masonry, and 630 cubic meters of concrete...
 
-　　这些数字对穿越众来说简直就是天文数字，所以全套的图纸都只能暂存，最后决定采取的是一种简单的渠道引水式发电站。安装一台200KW的发电机。
+These numbers were simply astronomical for the transmigrators, so the full set of drawings could only be temporarily stored. In the end, it was decided to adopt a simple channel-type diversion power station. A 200KW generator was installed.
 
-　　设计方案是首先在百仞滩九级瀑布的上游开挖了一条引水渠。引水渠的宽度和深度是根据水流和坡度的进行计算的，幸好这些是有现成的数据表可查的，最后确定为引水渠道的规模为底宽1.5米，水深1米。
+The design plan was to first excavate a diversion channel upstream of the nine-level waterfall of Bairen Tan. The width and depth of the diversion channel were calculated based on the water flow and slope. Fortunately, there were ready-made data tables for these, and it was finally determined that the scale of the diversion channel was a bottom width of 1.5 meters and a water depth of 1 meter.
 
-　　引水渠将水注入压力前池，这个池子连接着引水渠和压力管。由前室、拦污栅、闸门、进水室、溢水道和排沙口组成。
+The diversion channel injects water into a forebay, which connects the diversion channel and the pressure pipe. It consists of a forebay chamber, a trash rack, a gate, an intake chamber, a spillway, and a sand flushing outlet.
 
-　　压力前池是水电站的一个重要组成部分，不仅用来沉淀泥沙和拦截漂流杂物，以免进入水轮机造成损坏，在有多台机组的时候还能起到分配水量的作用。此外，它的最主要作用就是调节进入水轮机的水量大小。
+The forebay is an important part of a hydropower station. It is not only used to settle sediment and intercept floating debris to prevent them from entering the turbine and causing damage, but it can also play a role in distributing the water volume when there are multiple units. In addition, its most important role is to regulate the amount of water entering the turbine.
 
-　　当水电站负荷增大，水轮机所需要流量增加的时候，前室的蓄水池可以补充渠道来水不足，以免水位下降造成空气吸入压力水管，降低机组出力；反之，当负载突然减小，或者上游来水过多造成洪水时，渠道中的多余流量可以通过溢水道排出，以免影响建筑物安全。
+When the load of the hydropower station increases and the flow required by the turbine increases, the reservoir in the forebay chamber can supplement the insufficient water from the channel to prevent the water level from dropping and causing air to be sucked into the pressure pipe, which would reduce the output of the unit. Conversely, when the load suddenly decreases, or when there is too much water from upstream causing a flood, the excess flow in the channel can be discharged through the spillway to avoid affecting the safety of the buildings.
 
-　　水渠的闸门则是用来控制流量和截水，设置在压力前池的送水室内，因为是小型的水电站，这个闸门就决定使用了木材来制造。[王洛宾][y003]根据自己在农村的所见所闻，推荐使用了一种大跃进期间推广流行的木制弧形闸，它开启的时候使用滑轮组和手摇木绞车，关闭靠重力矩，结构简单，启闭快捷，使用起来极为方便。
+The gate of the channel is used to control the flow and intercept the water. It is set in the water delivery chamber of the forebay. Because it is a small hydropower station, it was decided to use wood to make this gate. [Wang Luobin][y003], based on what he had seen and heard in the countryside, recommended the use of a wooden arc gate that was popular during the Great Leap Forward. It used a pulley block and a hand-cranked wooden winch to open, and closed by gravity moment. The structure was simple, it opened and closed quickly, and it was extremely convenient to use.
 
-　　压力水管是建筑者们遇到的一个主要难题，它作为水电站用来造成压力水头驱动水轮机做功的重要部件，不仅要承受水头的压力，还要承受关闭水轮机导叶或者闸门时造成压力水管内水流骤然停止所产生的水锤压力。因此压力水管要有较大的强度，否则容易造成裂管事故。
+The pressure pipe was a major problem encountered by the builders. As an important component of a hydropower station used to create a pressure head to drive the turbine to do work, it not only had to withstand the pressure of the water head, but also the water hammer pressure generated by the sudden stop of the water flow in the pressure pipe when the turbine guide vanes or gates were closed. Therefore, the pressure pipe must have a large strength, otherwise it is easy to cause a pipe rupture accident.
 
-　　在现代，中小水电站一般都是使用钢管或者钢筋混凝土管，大口径钢管他们自然是没有，钢筋混凝土管的制造倒不成问题，但是对钢筋水泥的消耗太大，眼下还没有自产水泥和钢筋的能力，马上要用到的地方又太多。于是有人提议用陶管，但是陶管的抗拉强度差，10米水压下就会破裂，只能用小水头电站上，而且这么大的陶瓷件没人做过，在临高当地恐怕也不见得有人会烧制——再说到现在穿越者们还没找到一个陶窑——连砖窑都没发现。
+In modern times, small and medium-sized hydropower stations generally use steel pipes or reinforced concrete pipes. They naturally did not have large-diameter steel pipes, and the manufacture of reinforced concrete pipes was not a problem, but the consumption of steel bars and cement was too large. At present, they did not have the ability to produce their own cement and steel bars, and there were too many places where they would be needed immediately. So someone suggested using ceramic pipes, but the tensile strength of ceramic pipes was poor, and they would break under a water pressure of 10 meters. They could only be used in small-head power stations. Moreover, no one had ever made such a large ceramic part, and it was probably not possible to find someone in Lingao who could fire it—not to mention that the transmigrators had not yet found a pottery kiln—not even a brick kiln.
 
-　　[王洛宾][y003]考虑再三，提议采用木管。这种木制管道用厚4……6厘米的木板料拼接成，用铁箍箍紧，它的强度比混凝土管都要好，可在100米以下的水头高度使用，相比之下，混凝土管只能用于50米以下水头。木管保养的好的话，寿命也并不逊色，用上10……20年没用问题。
+[Wang Luobin][y003] considered it over and over again and proposed to use wooden pipes. This kind of wooden pipe was spliced together with wooden planks 4-6 cm thick and tightened with iron hoops. Its strength was better than that of concrete pipes and could be used at a water head height of less than 100 meters. In contrast, concrete pipes could only be used for water heads below 50 meters. If the wooden pipes were well maintained, their lifespan would not be inferior, and they could be used for 10-20 years without any problem.
 
-　　木料的问题比较容易解决，这些天伐木的工作一天也没有停止过，虽然缺少干燥设备，吴旷明还造了一个土窑，用枝叶慢熏的方式干燥木材，这种方法效率很低，干燥程度还不一致，不过总算是能提供足够的可用的木材了。
+The problem of wood was relatively easy to solve. The work of felling trees had not stopped for a single day these days. Although there was a lack of drying equipment, Wu Kuangming had built an earthen kiln and used the method of slow smoking with branches and leaves to dry the wood. This method was very inefficient and the degree of drying was not uniform, but it was able to provide enough usable wood.
 
-　　问题是用木板拼接管道并不容易，它有点象箍桶，这门手艺本来就快要失传了，更不用说制造这样大口径的木管道了。在经过若干次不成功的尝试之后，最后有人用CAD建模的方式分解了每一根拼接材的标准尺寸。木材组看着每根材料都精确到毫米，有着详细角度的加工图纸哭笑不得——我这里又没有数控锯木机。
+The problem was that it was not easy to splice pipes with wooden planks. It was a bit like coopering, and this craft was already on the verge of being lost, not to mention making such a large-diameter wooden pipe. After several unsuccessful attempts, someone finally used CAD modeling to break down the standard size of each spliced material. The wood group looked at the processing drawings with each material accurate to the millimeter and with detailed angles, and they didn't know whether to laugh or cry—I don't have a CNC sawing machine here.
 
-　　不过有了数字，摸索就有了方向。根据图纸的数据，又经过几天摸索，终于拼接出了第一根管道，长4米，直径0.7米，外用铁箍箍紧，经过简单的加水测试之后发现拼接强度还不够，在制造第二根管子时候又增加了铁箍和木料的厚度。试验合格之后，锯木厂立刻生产了32米的压力木管，其中12米为备用。事实证明这个备份是有必要的，在施工阶段报废了2根。管道之间的接口用水泥砂浆连接封固。压力管之间的支墩和镇墩则用水泥砂浆石砌。
+However, with the numbers, the exploration had a direction. Based on the data from the drawings and after a few days of exploration, the first pipe was finally spliced together. It was 4 meters long and 0.7 meters in diameter, and was tightened with iron hoops on the outside. After a simple water-filling test, it was found that the splicing strength was not enough. When making the second pipe, the thickness of the iron hoops and wood was increased. After the test was successful, the sawmill immediately produced 32 meters of pressure wooden pipes, of which 12 meters were for spare. It turned out that this backup was necessary, as 2 pipes were scrapped during the construction phase. The joints between the pipes were connected and sealed with cement mortar. The support piers and anchor blocks between the pressure pipes were built with cement mortar and stone.
 
-　　压力管的底部就是发电厂房，它的基座要求比较高，所以不惜工本用了碎石砂浆混凝土，部分用的是采石场里不知用途的各种各样尺寸的石条。
+At the bottom of the pressure pipe is the power plant building. Its foundation requirements are relatively high, so no expense was spared in using crushed stone mortar concrete. Some of the stone strips of various sizes of unknown use from the quarry were also used.
 
-　　尽管梅晚和他的建筑工程组以前没造过水电站，不过为农村设计的电站设备有详尽易懂的说明书。一群富于工程经验的人仔细研究，再加上各自对所目睹过的水电站的回忆，搞明白具体的建设方法的不难，开挖土方、沟渠，建造厂房，乃至架设电杆都是驾轻就熟。水渠是土渠，其他建筑物则都使用水泥砂浆石砌。
+Although Mei Wan and his construction engineering team had never built a hydropower station before, the power station equipment designed for rural areas had detailed and easy-to-understand instructions. A group of people with rich engineering experience studied it carefully, and with their respective memories of the hydropower stations they had seen, it was not difficult to figure out the specific construction methods. Excavating earthwork, ditches, building power plants, and even erecting power poles were all familiar tasks. The channel was an earthen channel, and other buildings were all built with cement mortar and stone.
 
-　　在某些石质的地段开挖比较费力，但是有空压机和风镐这些工具，也比较容易的克服了。本来执委会还拨给了一些硝氨和煤油，准备必要的时候用炸药施工，不过梅晚考虑还是少用这种大杀器为妙——他们都没有使用炸药的工程经验。
+Excavation was more difficult in some rocky sections, but with tools such as air compressors and pneumatic picks, it was relatively easy to overcome. The Executive Committee had also allocated some ammonium nitrate and kerosene, preparing to use explosives for construction when necessary, but Mei Wan considered it better to use this kind of big killer less—they had no engineering experience in using explosives.
 
-　　[王洛宾][y003]因为在广西农村生活工作过多年，对这种农村小水电之类的农用民生建筑很了解，最近的工程基本都是他在负责协调，在巡视工地的时候远远得看到水电站那边一群人围拢在一起，好像在争论着什么。他走近了点看见主要是建筑组和下属的工程队的人员在，一个是组长梅晚，另一个他有点印象，就是在公路基建的时候提出先修简易路的卓天敏。
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
+Because [Wang Luobin][y003] had lived and worked in the countryside of Guangxi for many years, he was very familiar with this kind of rural small hydropower and other agricultural and livelihood buildings. He was basically in charge of coordinating the recent projects. While inspecting the construction site, he saw a group of people gathered together at the hydropower station from a distance, as if they were arguing about something. He walked a little closer and saw that it was mainly the personnel of the construction team and its subordinate engineering team. One was the team leader Mei Wan, and the other he had some impression of, it was Zhuo Tianmin who had proposed to build a simple road first during the highway infrastructure construction.
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
 [y011]: /characters/y011 "罗铎"
