--- a/_posts/2009-11-15-2-02900.md
+++ b/_posts/2009-11-15-2-02900.md
@@ -1,88 +1,88 @@
 ---
 layout: post
-title: 第二十九节 水与电（二）
+title: Section 29: Water and Electricity (Part 2)
 category: 2
 path: 2009-11-15-2-02900.md
 tag: [normal]
 ---
 
-　　他对卓天敏没有特别深得印象，记得他有个儿子，曾经到执委会来找过[萧子山][y001]，要他批条子给[吴南海][y009]分个鸡蛋给他——给儿子吃的——鸡蛋眼下可是最紧俏的东西，每天只有三四个，一般只供应病号。
+He didn't have a particularly deep impression of Zhuo Tianmin. He remembered that he had a son who had once gone to the Executive Committee to find [Xiao Zishan][y001] and asked him to write a note to [Wu Nanhai][y009] to give him an egg—for his son to eat—eggs were the most sought-after item at the moment. There were only three or four a day, and they were generally only supplied to the sick.
 
-　　他三十五六岁的模样，穿着沾满石粉和泥土的作训服，指着那个新砌好的压力池，眼睛不看任何人，说：“……按设计图纸：进水室的底板比前室的底板要高。现在却造得一样高了。”
+He looked to be in his mid-thirties, wearing a training uniform stained with stone powder and mud. He pointed at the newly built pressure pool, not looking at anyone, and said, "...according to the design drawings: the bottom plate of the intake chamber should be higher than the bottom plate of the forebay. But now they are built at the same height."
 
-　　工程队的人围绕在他身边，都不作声。梅晚有点不耐烦：“就几公分的高低而已，有什么大不了的，样样都抠设计图纸的话这就是一豆腐渣工程。”
+The engineering team members surrounded him, all silent. Mei Wan was a little impatient: "It's just a few centimeters of difference, what's the big deal? If we have to follow the design drawings for everything, this will be a shoddy project."
 
-　　“那是缺材料搞得代用措施，没法子的事情，”卓天敏听他这么说，气不打一处来了，“这压力池的水泥石子黄沙一样都没少用，为什么不按图纸做？”
+"That's a substitute measure because of the lack of materials, there's no other way," Zhuo Tianmin said, getting angry when he heard this. "This pressure pool didn't skimp on cement, stones, or yellow sand. Why wasn't it built according to the drawings?"
 
-　　“工程队的人对图纸不了解，没注意……”冰风试图打圆场。
+"The engineering team members are not familiar with the drawings and didn't pay attention..." Bing Feng tried to smooth things over.
 
-　　“这更没道理。干活的都是生手，不是专业工人，责任不在他们，这没错。我们都是吃工程建筑饭的，这样的低级错误还好意思说？”周围的人都在交头接耳了。
+"That makes even less sense. The workers are all novices, not professional workers. The responsibility is not on them, that's right. We all make a living from engineering and construction. Are we still proud of such a low-level mistake?" The people around were all whispering.
 
-　　几个专业人员都红了脸，梅晚也驳不倒他，只好说：“那你说怎么办？”
+The faces of several professional personnel turned red. Mei Wan couldn't refute him either, so he had to say, "Then what do you suggest?"
 
-　　“砸掉了按图纸尺寸重新做。”
+"Tear it down and rebuild it according to the dimensions in the drawings."
 
-　　“这样浪费材料不说，还延误工期！”梅晚几乎要跳起来了，“再说你也不是水电专业出身，知道为什么池子前后要做成这有高低？图纸上的东西未必就是对的么，这样的事情多了。”
+"This will not only waste materials, but also delay the construction period!" Mei Wan almost jumped up. "Besides, you are not from a hydropower major. Do you know why the front and back of the pool are made at different heights? The things on the drawings are not necessarily right. There are many such things."
 
-　　“我的确不知道，不过正因为我们不懂，所以对图纸丝毫也不能含糊。”
+"I really don't know, but it's precisely because we don't know that we can't be vague about the drawings at all."
 
-　　这时有人发现了[王洛宾][y003]，说：“王委员来了！”
+At this time, someone discovered [Wang Luobin][y003] and said, "Committee Member Wang is here!"
 
-　　卓天敏听说[王洛宾][y003]来了，转身一看，[王洛宾][y003]果然站在人群里，他有礼貌的向[王洛宾][y003]点点头，不说了。
+When Zhuo Tianmin heard that [Wang Luobin][y003] had come, he turned around and saw that [Wang Luobin][y003] was indeed standing in the crowd. He politely nodded to [Wang Luobin][y003] and said no more.
 
-　　“卓工，你继续说呀。”
+"Engineer Zhuo, please continue."
 
-　　“我要说得都说完了，而且我的确也不懂水电建筑。王委员你来决定吧。”卓天敏冷淡的说。他要看看这执委会的委员到底有多少水平。大家的目光都集中在[王洛宾][y003]身上。
+"I've said everything I have to say, and I really don't know anything about hydropower construction. Committee Member Wang, you decide." Zhuo Tianmin said coldly. He wanted to see how capable this executive committee member was. Everyone's eyes were focused on [Wang Luobin][y003].
 
-　　[王洛宾][y003]围绕着池子走了一圈，又拿杆尺测量了下各部分的深度。检查完了，他向卓天敏征求意见说：“卓工，你看怎么办好？”
+[Wang Luobin][y003] walked around the pool and measured the depth of each part with a measuring rod. After the inspection, he asked Zhuo Tianmin for his opinion, "Engineer Zhuo, what do you think we should do?"
 
-　　卓天敏说：“不按图纸施工就是质量不合格，唬弄是可以的，就怕以后会出问题。”
+Zhuo Tianmin said, "Not building according to the drawings means the quality is not up to standard. It's okay to muddle through, but I'm afraid there will be problems in the future."
 
-　　[王洛宾][y003]转身问梅晚：“你看呢？”
+[Wang Luobin][y003] turned to Mei Wan and asked, "What do you think?"
 
-　　梅晚想了一下，说：“的确是和图纸有出入，但是现在材料少，又得赶日期，我看可以将就使用！以后有了条件再改。”
+Mei Wan thought for a moment and said, "It is indeed different from the drawings, but now we are short of materials and have to meet the deadline. I think we can make do with it! We can change it later when we have the conditions."
 
-　　这个提议得到了一部分建筑组人员的赞同。
+This proposal was approved by some of the construction team members.
 
-　　[王洛宾][y003]点点头，说：“如果重新返工，要浪费一些水泥、钢筋，还会延误发电并网的时间，但是这个事情却不能将就。”
+[Wang Luobin][y003] nodded and said, "If we rework it, we will waste some cement and steel bars, and it will also delay the time for power generation and grid connection, but this matter cannot be compromised."
 
-　　他指了下池子：“压力前池的宽度和深度要比渠道大，是为了水流进入前池之后减慢流速，这样水里的泥沙就会沉淀下来，这是第一步，进水室比前室底部高一些，是为了防止已经沉淀下来的泥沙冲入压力水管。保证水轮机的安全运行。”
+He pointed to the pool: "The width and depth of the forebay should be larger than the channel, so that the water flow slows down after entering the forebay, and the sediment in the water will settle down. This is the first step. The bottom of the intake chamber is higher than the bottom of the forebay to prevent the settled sediment from rushing into the pressure pipe. This ensures the safe operation of the turbine."
 
-　　梅晚知道这件事情上自己又领会错了执委会的意思，修筑公路的经验使他以为执委会主要看工程速度，所以这次就坚持进度优先。眼看着建筑队的人大眼瞪小眼的都看着他，没有好气的挥了下手：
+Mei Wan knew that he had once again misunderstood the meaning of the Executive Committee on this matter. The experience of building the highway made him think that the Executive Committee mainly looked at the speed of the project, so this time he insisted on prioritizing the progress. Seeing that the people in the construction team were all staring at him, he waved his hand in annoyance:
 
-　　“别看了，快把有问题的地方都砸掉，返工！”
+"Stop looking, quickly tear down the problematic parts and rework them!"
 
-　　建筑队跳下池子拿八磅的锤子敲打着要返工的地方，混凝土块剥落着掉了下来，[王洛宾][y003]一阵心疼，水泥这东西也不知道什么时候才能做出来，远程侦察队正是为了寻找各种资源才被派出去的，现在已经走了快一周了，虽然每天都有无线电联络，但是资源勘探情况还没汇报过来……
+The construction team jumped into the pool and began to knock on the parts that needed to be reworked with an eight-pound hammer. The concrete blocks peeled off and fell. [Wang Luobin][y003] felt a pang of heartache. He didn't know when they would be able to make cement. The long-range reconnaissance team was sent out precisely to find various resources. They had been gone for almost a week now. Although there was radio contact every day, the resource exploration situation had not yet been reported...
 
-　　卓天敏站在一旁注视着[王洛宾][y003]，似乎今天才认识[王洛宾][y003]。平时他对这些执委的印象就是和气而圆滑，[萧子山][y001]这类就是典型，永远不说一句让你不高兴的话，但是你分辨不出他对某件事情的态度，即使是要在某些争端中充当决策者，他也会用一套言辞让大家都觉得不伤面子——他很佩服这样的人，但是同时又看不起，觉得这是自身没有专业的人才会搞得一种生存手段。
+Zhuo Tianmin stood aside and watched [Wang Luobin][y003], as if he had only met [Wang Luobin][y003] today. His usual impression of these executive committee members was that they were amiable and slick. [Xiao Zishan][y001] was a typical example. He would never say a word that would make you unhappy, but you couldn't tell his attitude towards a certain matter. Even if he had to act as a decision-maker in some disputes, he would use a set of words to make everyone feel that they had not lost face—he admired such people, but at the same time, he looked down on them, feeling that this was a survival means for people who had no profession.
 
-　　他何尝不知道自己在建筑工程组里几次发言之后已经成了梅晚的忌讳，但他一点都不在乎——自己不就是为了离开那个虚伪空洞的生活环境才带着儿子来到这里的吗？如果到了另外一个时空还要继续搞那一套，那他何必来呢？
+He knew very well that he had become a taboo for Mei Wan after speaking out in the construction engineering team several times, but he didn't care at all—wasn't it to leave that hypocritical and empty living environment that he brought his son here? If he had to continue that set of things in another time and space, why would he come?
 
-　　风很大，枝条柔软的树木起劲的摇晃着，百仞滩这里的植被保持的比其他地方要好，附近连绵的矮丘陵上的树林茂密，随着风传来一阵阵的树涛。风忽然变大，天气也阴沉下来，有点要下雨的样子。返工的部分砸掉之后，梅晚立刻重新组织了力量，亲自带领工程队抢修，浇注的混凝土的工作要抢在降雨以前完成。[王洛宾][y003]也在工地协助清理残渣，他边干边思索，正如[文总][y002]在私下里和他谈得一样，团体里的事情并不像想像的那么简单，从这些天他组织安排施工的前后来看，建筑组内部显然已经有了裂痕。
+The wind was very strong, and the trees with soft branches swayed vigorously. The vegetation here at Bairen Tan was better preserved than in other places. The forests on the nearby rolling low hills were dense, and the sound of the wind blowing through the trees came in waves. The wind suddenly became stronger, and the weather also became gloomy, looking like it was about to rain. After the reworked parts were torn down, Mei Wan immediately reorganized his forces and personally led the engineering team to rush the repairs. The work of pouring the concrete had to be completed before the rain. [Wang Luobin][y003] was also on the construction site helping to clean up the debris. As he worked, he thought, just as [Wen Zong][y002] had talked to him in private, the affairs in the group were not as simple as imagined. From the way he had organized and arranged the construction these days, it was clear that there were already cracks within the construction team.
 
-　　重新浇注完混凝土之后，马上开始安装水轮机。水轮机安装要求比较高，要测水平，最好是一次性吊装到位，梅晚调来了那台汽吊，经过一下午的折腾，终于把水轮机吊装到位。发电机房因为没有砖瓦可用，暂时就先搭建了一个棚子作为遮盖。
+After the concrete was re-poured, the installation of the turbine began immediately. The installation of the turbine had high requirements. The level had to be measured, and it was best to hoist it into place in one go. Mei Wan called over the steam crane. After an afternoon of tossing and turning, the turbine was finally hoisted into place. Because there were no bricks and tiles available for the generator room, a shed was temporarily built as a cover.
 
-　　工程队冒着细雨清理干净工地上碎石和垃圾，安装好引水渠闸门，最后将取水口的土石完全挖开。弧形木闸门发挥了它的作用，水没有涌入，现在就等混凝土完全干透即可发电。
+The engineering team, braving the light rain, cleaned up the rubble and garbage on the construction site, installed the diversion channel gate, and finally completely dug out the soil and stones at the water intake. The arc-shaped wooden gate played its role, and the water did not rush in. Now they just had to wait for the concrete to dry completely before they could generate electricity.
 
-　　这座水头20米，水流量每秒两立方米的小水电站，可以为基地提供200KW的电力。未来的远景规划是达到5台机组1000KW的发电功率。
+This small hydropower station with a water head of 20 meters and a water flow of two cubic meters per second could provide 200KW of electricity for the base. The future long-term plan was to reach a power generation capacity of 1000KW with 5 units.
 
-　　因为即将有二台发电机同时发电，原先简单的拉电线供电的模式就要有所改变。[常凯申][y010]计划建立起新的电网系统。系统是成套采购的，这个电力网将采用110千伏电压高压送电，用电则采用工业380伏和民用220伏，这都是本时空现成的电压标准，也符合他们带来的各种机械设备的用电需求。
+Because two generators would be generating electricity at the same time, the original simple mode of pulling wires for power supply had to be changed. [Chang Kaishen][y010] planned to establish a new power grid system. The system was purchased as a complete set. This power grid would use 110 kV high-voltage power transmission, and the electricity consumption would use industrial 380 volts and civil 220 volts. These were all existing voltage standards in this time and space, and also met the power consumption needs of the various mechanical equipment they brought.
 
-　　电网的输电线路梅晚为了安全起见原打算都安装在地下，但是没有合适的耐腐蚀的电缆套管，所以继续采用电线杆架空输电，好在从水电区到主城区的线路全长才100米，完全在视线范围之内。如果有必要，可以用城墙把两个区域之间连接起来，不过暂时还没这个必要。
+For the sake of safety, Mei Wan originally planned to install all the transmission lines of the power grid underground, but there were no suitable corrosion-resistant cable conduits, so they continued to use overhead power transmission with utility poles. Fortunately, the total length of the line from the hydropower area to the main urban area was only 100 meters, which was completely within sight. If necessary, the two areas could be connected with a city wall, but there was no need for that for the time being.
 
-　　有了电，接下来的项目是供水系统。文澜河的水质主要是受到上游县城居民区和农田的废水废物的污染，故而有机质含量比较高，水藻较多，泥沙含量反而很小。对于这样的水质，仅仅依靠传统的泥沙沉淀、消毒的方法是不够的，水藻会带来难闻的臭味，连氯气的味道都掩盖不了，太湖无锡段的蓝藻大爆发的时候，当时自来水厂出厂的水质在理化标准上完全合格，但是臭味却始终不能消除。
+With electricity, the next project was the water supply system. The water quality of the Wenlan River was mainly polluted by the wastewater and waste from the residential areas and farmland in the upstream county town, so the organic matter content was relatively high, there were many algae, and the sediment content was very small. For this kind of water quality, it was not enough to rely solely on the traditional methods of sediment precipitation and disinfection. The algae would bring an unpleasant smell that even the smell of chlorine could not cover up. During the large-scale blue-green algae bloom in the Wuxi section of Taihu Lake, the water quality of the tap water factory at that time was fully qualified in terms of physical and chemical standards, but the smell could not be eliminated.
 
-　　田九九作为给排水的专业人士，在查堪过水文地形后，决定采取渗滤式取水口——河水通过河边土壤的渗滤再进入到蓄水池，这种形式取到的水通常不受污染，不需要太多的处理。
+Tian Jiujiu, as a professional in water supply and drainage, after inspecting the hydrological terrain, decided to adopt a percolation intake—the river water would first percolate through the soil on the river bank and then enter the reservoir. The water obtained in this way was usually not polluted and did not require much treatment.
 
-　　最简单的模式是挖掘渗滤井。不过田九九考虑到要供应的人口数量多，现代人的生活习惯用水量也较大，所以采用的是比较复杂一些的渗滤廊道给水系统。
+The simplest model is to dig a percolation well. However, Tian Jiujiu considered that the population to be supplied was large, and the water consumption of modern people's living habits was also large, so he adopted a more complex percolation gallery water supply system.
 
-　　首先在沿河15米的地方，平行着河岸开挖一条集水管沟，集水沟的开挖深度要低于最低水位线1米，管沟内是由多层不同规格的砂、砾石和小碎石组成的滤床，滤床中间埋设集水管道，这种管道在现代一般是用50……100mm直径的打孔PVC塑料管，田九九没这种PVC塑料管，所以采用了混凝土管，用200mm圆径的圆木作为内模，用砾石、细纱和水泥混合后现场浇注成型。这种管道不需要太密实，而是要求疏松多孔，管道接口的地方也不用密封——以便到进入集水沟里的地下水能渗透进管道里去。整个管沟用不少于30mm厚度的泥土进行覆盖。
+First, a water collection pipe trench was dug parallel to the river bank at a distance of 15 meters from the river. The excavation depth of the water collection trench had to be 1 meter below the lowest water level line. The pipe trench was a filter bed composed of multiple layers of sand, gravel, and small crushed stones of different specifications. A water collection pipe was buried in the middle of the filter bed. In modern times, this kind of pipe is generally a perforated PVC plastic pipe with a diameter of 50-100mm. Tian Jiujiu did not have this kind of PVC plastic pipe, so he used a concrete pipe. A round log with a diameter of 200mm was used as the inner mold, and it was cast in place with a mixture of gravel, fine sand, and cement. This kind of pipe did not need to be too dense, but was required to be loose and porous. The joints of the pipes were not sealed—so that the groundwater entering the water collection trench could seep into the pipe. The entire pipe trench was covered with a layer of soil no less than 30mm thick.
 
-　　最后，在管沟的北面尽头，地势最低处，用混凝土砂浆砌石修筑清水井，渗入集水管的清水最终被流淌到这里沉淀。建筑工程组为这个水井做了一个钢筋混凝土盖子。沉淀后的清水用泵泵入高架水塔。水塔的基座是用石块和水泥砂浆砌起来的，上面安装了一个从船上拆下来的十吨水箱，水箱外面涂上了一层用作防水防锈的水泥砂浆，水塔外安装有一个臭氧发生器，这个装置用高频电子装置产生臭氧用于杀菌，臭氧杀菌效果并不比氯气差，而且不需要复杂的电解装置和管道，对人体也没有很大危害，在电解食盐装置没有上马前，这个东西能顶很长时间。
+Finally, at the northern end of the pipe trench, at the lowest point of the terrain, a clear water well was built with concrete mortar and stone. The clear water that seeped into the water collection pipe was finally flowed here to settle. The construction engineering team made a reinforced concrete cover for this well. The settled clear water was pumped into an elevated water tower by a pump. The base of the water tower was built with stones and cement mortar. A ten-ton water tank dismantled from a ship was installed on top. The outside of the water tank was coated with a layer of cement mortar for waterproofing and rust prevention. An ozone generator was installed outside the water tower. This device used a high-frequency electronic device to generate ozone for sterilization. The sterilization effect of ozone was not worse than that of chlorine, and it did not require a complex electrolysis device and pipelines, and it was not very harmful to the human body. Before the salt electrolysis device was put into operation, this thing could last for a long time.
 
-　　为了防备台风，整个高塔水箱用粗大的船用缆绳牢牢斜拉在地面上。通往主城区的主输水管道是PVC材质的，因为建筑组规模宏大的地下市政暗沟工程还没开工，这条输水管道暂时埋设在浅沟里。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
-[y009]: /characters/y009 "吴南海"
+In order to prevent typhoons, the entire elevated water tank was firmly anchored to the ground with thick ship cables. The main water transmission pipeline to the main urban area was made of PVC material. Because the construction team's large-scale underground municipal culvert project had not yet started, this water transmission pipeline was temporarily buried in a shallow trench.
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
+[y009]: /characters/y009 "Wu Nanhai"
 [y010]: /characters/y010 "常凯申"
