--- a/_posts/2009-11-16-2-03000.md
+++ b/_posts/2009-11-16-2-03000.md
@@ -1,100 +1,100 @@
 ---
 layout: post
-title: 第三十节 电信
+title: Section 30: Telecommunications
 category: 2
 path: 2009-11-16-2-03000.md
 tag: [normal]
 ---
 
-　　为穿越者们修建住宅的工程也随之展开，比起前面的几项基础建设，这个工程简单多了，简易房都是搭积木一样的标准件构造，施工并不困难。
+The project of building residences for the transmigrators also began. Compared to the previous few infrastructure projects, this one was much simpler. The prefabricated houses were all constructed with standard parts like building blocks, so the construction was not difficult.
 
-　　住宅区的地基已经被适当的垫高2米，一是为了防止可能发生的洪水，二来万一遭到进攻的时候也能居高临下的进行抵抗。整个地基的斜坡都用石块砌坡，地面则做了硬化处理。简易房采用新村里常见的行列式的布局，所有房屋统一坐北朝南向排列，围绕中心广场布置成七个组团，分别用阿拉伯数字按顺时针方向编号，其中一到五组团是男子单身宿舍，六组团为女子单身宿舍，七组团为家庭单位。每间单身宿舍住4人，家庭则每家拥有一间。简易房内按照过去的想法，尽可能的配置了舒适的环境，安装了电灯、电源插座，不过没有家具——眼下的木料都得优先供应基建工程——即使这样，也让很多人感到高兴了，十多天来第一次可以睡在一间真正的房子里，笔记本又能充上电了，夜晚的生活不再枯燥……
+The foundation of the residential area has been appropriately raised by 2 meters. Firstly, to prevent possible floods, and secondly, to be able to resist from a high position in case of an attack. The entire slope of the foundation was paved with stones, and the ground was hardened. The prefabricated houses adopted the common row-style layout in new villages. All houses were arranged in a north-south direction, arranged in seven groups around the central square, numbered in clockwise order with Arabic numerals. Among them, groups one to five were male dormitories, group six was a female dormitory, and group seven was for family units. Each single dormitory housed 4 people, and each family had one room. Inside the prefabricated houses, according to past ideas, a comfortable environment was configured as much as possible. Electric lights and power sockets were installed, but there was no furniture—the current wood had to be prioritized for infrastructure projects—even so, it made many people happy. For the first time in more than ten days, they could sleep in a real house, their laptops could be charged again, and their nightlife was no longer boring...
 
-　　生活区广场上搭建了成排的晾衣架，广场的北面的一排房屋则是厕所和盥洗室。从船上卸下了全新的抽水马桶——不是家庭用的座便器，而是俗称“土耳其式马桶”的蹲便器——执委会觉得这种不与皮肤直接接触的洁具更卫生一些。冲洗厕所用的水是直接从河里抽来的，储存在厕所后面的一个简易水塔里，百仞城从建城伊始就开始了分质供水。
+Rows of clotheslines were set up on the square of the living area, and the row of houses on the north side of the square were toilets and washrooms. Brand new flush toilets were unloaded from the ship—not the pedestal toilets used in homes, but the squat toilets commonly known as "Turkish toilets"—the Executive Committee felt that this kind of sanitary ware that did not come into direct contact with the skin was more hygienic. The water used to flush the toilets was drawn directly from the river and stored in a simple water tower behind the toilets. Bairen City had started to supply water of different qualities from the very beginning of its construction.
 
-　　盥洗室和厕所采用的是同一套的排水设施，这些污水在高度差的重力作用下通过污水渠直接排入住宅区下风处的农业区，[吴南海][y009]建造了一个大沼气池，城里所有的污水都在这里进行处理。
+The washrooms and toilets used the same drainage facilities. This sewage was directly discharged into the agricultural area downwind of the residential area through the sewage channel under the action of gravity due to the height difference. [Wu Nanhai][y009] built a large biogas digester, and all the sewage in the city was treated here.
 
-　　整个生活区的外围用土石堆砌成一人高的矮墙，必要的时候可以利用它进行抵抗，出入生活区的入口只有一处，台阶上大门用结实的木板做成，旁边是一个石块水泥砂浆造的二层楼的值班室——实际上是一个碉堡，这里在平时安排治安组的人员24小时值班。
+The entire periphery of the living area was piled up with earth and stones to form a one-man-high low wall, which could be used for resistance when necessary. There was only one entrance to the living area. The gate on the steps was made of sturdy wooden boards, and next to it was a two-story duty room made of stone and cement mortar—actually a blockhouse. The security team personnel were arranged to be on duty here 24 hours a day.
 
-　　执委会的办公环境也跟着改善，一栋二层的钢架简易房的组合楼拔地而起，这里的内装就要气派多了，家具都是从丰城轮上取下来的——这些过去看起来很旧的老款家具如今看起来即豪华又气派，让很多人眼红。办公室里甚至还有局域网！群众中有人传说，执委会的一些人每天晚上都在办公室里联机打游戏。
+The office environment of the Executive Committee also improved. A two-story steel-frame prefabricated composite building rose from the ground. The interior decoration here was much more magnificent. The furniture was all taken from the Fengcheng ship—these old-style furniture that looked very old in the past now looked both luxurious and magnificent, making many people envious. There was even a local area network in the office! It was rumored among the masses that some people in the Executive Committee played online games in the office every night.
 
-　　这给刚刚在执委会大楼里拿到一个办公室的通讯组很大的压力，许多人都来找组长李运兴要求尽快把网络接口通到每间屋子，还有人担心没有那么多的路由器，一个房间一个接口的话大家没法同时上网了。就干脆建议全面开放无线上网服务，反正多数人带的笔记本都有这个功能。
+This put a lot of pressure on the communications team, which had just gotten an office in the Executive Committee building. Many people came to the team leader, Li Yunxing, to ask for the network interface to be connected to every room as soon as possible. Some people were also worried that there were not enough routers, and if each room had one interface, everyone would not be able to go online at the same time. So they simply suggested that wireless internet service be fully opened, since most people's laptops had this function anyway.
 
-　　这个要求被执委会无情的否决了，[马千瞩][y005]指示他尽快在百仞城设立通信中心。
+This request was ruthlessly rejected by the Executive Committee. [Ma Qianzhu][y005] instructed him to set up a communication center in Bairen City as soon as possible.
 
-　　通讯组在穿越前的通讯计划里采取的方案实际就是现在已经被淘汰的小灵通系统，当然这种通讯系统在现实中运用并不太理想，很多时候都是属于“喂喂操”。但是它作为一种穿越通讯器材却有结构简单，能耗小的特点，至于信号差的问题，17世纪的空气里是没有无线电干扰的，也没有林立的大楼和高压线。
+The solution adopted by the communications team in the pre-transmigration communication plan was actually the now-obsolete PHS system. Of course, this communication system was not ideal in reality, and it was often a case of "hello, hello, can you hear me?". But as a transmigration communication device, it had the characteristics of simple structure and low energy consumption. As for the problem of poor signal, there was no radio interference in the air of the 17th century, nor were there towering buildings and high-voltage lines.
 
-　　李运兴带了一套本地电信废弃不用的小灵通基站和控制器，还有笔记本2台、电信淘汰服务器、各类通讯线材、接口设备、通讯协议、通讯管理软件等全套通讯类管理软件。这些东西足够他在这个时空建造一个无线通讯网络了。
+Li Yunxing brought a set of abandoned PHS base stations and controllers from the local telecommunications company, as well as 2 laptops, obsolete telecommunications servers, various communication cables, interface equipment, communication protocols, and a full set of communication management software. These things were enough for him to build a wireless communication network in this time and space.
 
-　　这样一套小灵通基站和控制器，可以在最大几十公里的半径内支持上千个小灵通手机，如果增加几个远端模块还可以支持更远的距离，相当时期内基地内部通讯都够用了。
+Such a set of PHS base stations and controllers could support thousands of PHS mobile phones within a radius of up to several tens of kilometers. If a few remote modules were added, it could support a longer distance, which would be enough for internal communication in the base for a considerable period of time.
 
-　　还有一千多个小灵通手机，都是批量买同一个信号同一个批次的，这样到时候可以零部件替换修理。
+There were also more than a thousand PHS mobile phones, all of which were purchased in batches with the same signal and the same batch number, so that parts could be replaced and repaired in the future.
 
-　　他估算了一下，现有的基站发射功率是50w左右，大概能够覆盖15km的蜂窝区，若要满足执行委员的要求，基站覆盖范围应要达到35km……40km左右，则应该加装基站功率放大器，使每通道发射功率增大到200w，这样可以同时大幅增加系统的衰落储备，为了平衡功率，同样要装上塔顶放大器，使上行信号增加12db左右。总体估算，整个基站用230v50hz交流供电，所需功率为7－10kw。当下把报告交到执行委员会要求给予供电配额，不过现在锅驼机电站就能每小时提供200KW电量，这点功率应该不成问题。
+He estimated that the transmission power of the existing base station was about 50w, which could probably cover a cellular area of 15km. To meet the requirements of the executive committee members, the coverage of the base station should reach about 35km...40km. In that case, a base station power amplifier should be installed to increase the transmission power of each channel to 200w. This could also greatly increase the system's fading margin. To balance the power, a tower top amplifier should also be installed to increase the uplink signal by about 12db. The overall estimate was that the entire base station would be powered by 230v50hz AC, and the required power would be 7-10kw. He immediately submitted a report to the Executive Committee to request a power supply quota. However, the portable steam engine power station could now provide 200KW of electricity per hour, so this amount of power should not be a problem.
 
-　　通讯组申请工程队的帮忙，在城内搭建了一个塔架，安装了阵列天线，这样可以减少周围建筑物的回波噪声，当然此时此地也没什么高层建筑，但是架高一点总没错。
+The communications team applied for the help of the engineering team to build a tower in the city and install an array antenna. This could reduce the echo noise of the surrounding buildings. Of course, there were no tall buildings at this time and place, but it was always right to raise it a little higher.
 
-　　[文总][y002]提议，应该尽快把各种无线资源整合起来，使电台、手机、步话机可以互相通话。对这种合理要求，李运兴冥思苦想了半天，又把组员都召集起来研究了一番，最后只好采用一种土办法来解决：利用空中公共接口协议，为大家的步话机提供集群调度——临时用工业用的单片机组建了一个服务器，把步话机的信号模拟成手机信号接入交换机中，这个方案不仅需要单片机，由于小灵通和步话机之间的频率不同，又加装了一个天线。
+[Wen Zong][y002] proposed that various wireless resources should be integrated as soon as possible so that radios, mobile phones, and walkie-talkies could communicate with each other. In response to this reasonable request, Li Yunxing thought hard for a long time, and then gathered all the team members to study it. In the end, they had to adopt a crude method to solve it: using the air common interface protocol to provide cluster scheduling for everyone's walkie-talkies—they temporarily used an industrial single-chip microcomputer to build a server, simulating the walkie-talkie signal as a mobile phone signal and connecting it to the switch. This solution not only required a single-chip microcomputer, but also an additional antenna due to the different frequencies between PHS and walkie-talkies.
 
-　　小灵通的开通使用使得每个人都找回了一丝熟悉的感觉，在放号发手机的那天，通讯组办公室前人头攒动，大家都想要一个所谓的吉利号码。
+The opening and use of PHS brought back a sense of familiarity to everyone. On the day of number allocation and mobile phone distribution, the communications team office was crowded with people, and everyone wanted a so-called lucky number.
 
-　　“我要888888！”
+"I want 888888!"
 
-　　“我要168168！一路发！”
+"I want 168168! A prosperous journey!"
 
-　　“放屁，那是我的。”
+"Bullshit, that's mine."
 
-　　“小绍，你还记得吗？我还请你吃过饭呢，给我留个带8的！”
+"Little Shao, do you remember me? I even treated you to a meal. Save me one with an 8!"
 
-　　“你们这群人真庸俗，就知道要8，扒皮？”
+"You people are so vulgar, you only want 8, skinning?"
 
-　　“这叫发，发财！你懂不？文盲！”
+"This is called 'fa', getting rich! Do you understand? Illiterate!"
 
-　　“你才是文盲，你们全家都是文盲，你又不是广东佬，跟这人学什么舌头？”这两个人几乎拳脚相交起来。
+"You are the illiterate one, your whole family is illiterate. You are not a Cantonese, why are you learning to speak like them?" These two people almost came to blows.
 
-　　“我要6，给我带6的！”
+"I want 6, give me one with a 6!"
 
-　　还有人别出心栽的：“我要444444！”
+Someone else had a different idea: "I want 444444!"
 
-　　“那你不如要514514！”有人开他的玩笑。
+"Then you might as well have 514514!" someone joked with him.
 
-　　绍宗坐在桌子背后，桌子上放着个大箱子，扯起喉咙喊：“大家不要乱，挨个来，我们这里依次摸号，没选号的，知道不？摸到那个是那个。哎哎哎，我说你这么不自觉啊，看了又丢回去？！没素质！”
+Shao Zong sat behind the table, with a large box on the table, and shouted at the top of his lungs, "Everyone, don't be chaotic, come one by one. We are drawing numbers in order here, no choosing numbers, you know? You get what you draw. Hey, hey, hey, I say you are so undisciplined, you look at it and throw it back?! No quality!"
 
-　　“哎，小绍啊，能不能给我个好看点的？这手机也太难看了。”这是女生在发话了。
+"Hey, Little Shao, can you give me a better-looking one? This phone is too ugly." This was a girl speaking.
 
-　　“我要翻盖的那种。你们怎么都是直板的？老土！”女人们叽叽喳喳地说着，她们的兴趣不在号码上而是那边的一堆小灵通手机——都在那里乱翻。
+"I want the flip-top kind. Why are all of yours candy bars? So old-fashioned!" The women chattered, their interest was not in the numbers but in the pile of PHS phones over there—they were all rummaging through them.
 
-　　“是啊，颜色也没得选……早知道我把我丢家里不要的那个带来了……”这些手机是批量采购的，除了颜色有些不同，款式型号都是一模一样的，难怪女孩子们不满意了。
+"Yeah, there's no choice of color... If I had known, I would have brought the one I threw away at home..." These phones were purchased in batches. Except for some differences in color, the styles and models were all the same. No wonder the girls were not satisfied.
 
-　　通讯组的几个人拼命的维持秩序，但是眼看场面愈来愈混乱，一直在附近干活的郭逸同学站了出来：
+The few people in the communications team tried their best to maintain order, but seeing the scene getting more and more chaotic, Comrade Guo Yi, who had been working nearby, stood up:
 
-　　“大家不要乱，”他没干过治安这行，到底也算是一个行业中人，没吃过猪肉总见过猪跑。眼看这样的情况下正是表现的时候，马上站出来帮忙维持秩序。有个性情暴躁的家伙企图推搡小郭同学，被他一个关节擒拿捏得直掉眼泪，有了这么个可悲的榜样，闹哄哄的人群马上安定下来了。
+"Everyone, don't be chaotic," he had never worked in security, but he was still in the industry. He had seen pigs run even if he hadn't eaten pork. Seeing that this was a time to show off, he immediately stood up to help maintain order. A hot-tempered guy tried to push Little Guo, but was caught in a joint lock and cried out in pain. With such a pathetic example, the noisy crowd immediately quieted down.
 
-　　选号很快就结束了，除了少数幸运儿获得了所谓的带8带6的吉利号码之外，多数人都是普通的号码。有些特别信这个又没抽到号的人心有不甘的咒骂着，去找那些幸运儿，提出用自己的物资装备和他们换号。
+The number selection was over soon. Except for a few lucky ones who got the so-called lucky numbers with 8s and 6s, most people got ordinary numbers. Some people who particularly believed in this and didn't get a lucky number cursed with dissatisfaction and went to find the lucky ones, proposing to exchange their own materials and equipment for their numbers.
 
-　　“商机在任何地方都有啊……”绍宗心满意足的把桌子搬回了办公室，和另一个时空一样，通讯组——未来的穿越电信公司，已经把那些所谓的吉利号码都扣留了下来，李运兴和绍宗盘算着一旦穿越电信改制，他们再把这些号码投放市场，乖乖，那不是发财了？
+"There are business opportunities everywhere..." Shao Zong moved the table back to the office with satisfaction. Just like in another time and space, the communications team—the future Transmigration Telecom Company—had already withheld those so-called lucky numbers. Li Yunxing and Shao Zong were planning that once Transmigration Telecom was restructured, they would release these numbers to the market. Good heavens, wouldn't they be rich?
 
-　　看到站出来维持秩序的人没取号就走了，他赶紧追了上去：
+Seeing that the person who stood up to maintain order had left without taking a number, he quickly chased after him:
 
-　　“兄弟，你叫什么？怎么不取号领手机呢。”他决定为了表示谢意要给他一个带8的号码。
+"Brother, what's your name? Why didn't you take a number and get a phone?" He decided to give him a number with an 8 to show his gratitude.
 
-　　“这个，”郭逸抓了抓脑袋，有点难为情的说，“我是临时身份证，现在不能领手机。”
+"Well," Guo Yi scratched his head and said with some embarrassment, "I have a temporary ID card, so I can't get a phone now."
 
-　　“哦！”绍宗恍然大悟地拍了下手，“你是那个郭逸吧。”
+"Oh!" Shao Zong slapped his hand in sudden realization. "You are that Guo Yi, right?"
 
-　　“你知道我？”小郭有点不明白，他在这里应该是没人认得他才对。
+"You know me?" Little Guo was a little confused. He shouldn't be recognized by anyone here.
 
-　　“嗯，其他人是不知道了，不过我们组长拿回来的内部通报，我看过。”
+"Well, other people don't know, but I've read the internal report that our team leader brought back."
 
-　　“哦？上面说什么。”郭逸对自己的未来很关注，内部通报无疑代表了这群大胆的时空冒险者的高层对自己的看法和政策。
+"Oh? What does it say?" Guo Yi was very concerned about his future. The internal report undoubtedly represented the views and policies of the senior management of this group of bold time-space adventurers towards him.
 
-　　“这个……”绍宗为难地想了想，“不方便说了，是有秘级的……”
+"Well..." Shao Zong thought for a moment with difficulty, "It's not convenient to say, it's classified..."
 
-　　他妈的，还真是有样学样，这套玩意倒是一学就精通。小郭在心里暗暗骂了句，不过脸上还是无比诚恳地说：“没关系，我就随便一问。”
+Damn it, they really learn by example. They are so proficient in this set of things. Little Guo cursed secretly in his heart, but his face was still extremely sincere as he said, "It's okay, I was just asking casually."
 
-　　“我就露一点了吧，”绍宗觉得太讲原则性未免不近人情，“你们三个人么，执委会的意思是要有所区别的。你记得这点就好了。”
+"I'll just reveal a little bit," Shao Zong felt that being too principled was a bit inhuman. "As for the three of you, the Executive Committee's meaning is that there should be a distinction. You just need to remember this."
 
-　　有所区别？这是什么意思，郭逸一时间陷入了沉思。
-[y002]: /characters/y002 "文德嗣"
-[y005]: /characters/y005 "马千瞩"
-[y009]: /characters/y009 "吴南海"
+A distinction? What does that mean? Guo Yi fell into deep thought for a moment.
+[y002]: /characters/y002 "Wen Desi"
+[y005]: /characters/y005 "Ma Qianzhu"
+[y009]: /characters/y009 "Wu Nanhai"
