--- a/_posts/2009-11-17-2-03100.md
+++ b/_posts/2009-11-17-2-03100.md
@@ -1,73 +1,73 @@
 ---
 layout: post
-title: 第三十一节 临高的反攻（一）
+title: Section 31: Lingao's Counterattack (Part 1)
 category: 2
 path: 2009-11-17-2-03100.md
 tag: [normal]
 ---
 
-　　所谓三个人有所区别，显然是说他和ATF的两个洋人是有所区别的——在未来他们的待遇和发展就根据这个区别有所不同。至于是好是坏，这个就很难讲了。
+The so-called distinction between the three people obviously meant that he was different from the two foreigners from the ATF—in the future, their treatment and development would differ based on this distinction. As for whether it was good or bad, it was hard to say.
 
-　　从好的一面来说，他是中国人，另外二个是美国人，从非我族类其心必异的考虑，他显然属于“可以团结的对象”。但是从某些国人一贯喜欢优待洋大人的思维来说，保不定这二个无根无底的外国友人更受这群领导者的器重，自己反而成了一个企图破坏他们计划的可恶之徒——要是这样，他最好的下场也就是“控制使用”。
+On the bright side, he was Chinese, and the other two were Americans. Considering that "those who are not of my race must have a different heart," he was clearly a "target that can be united with." But from the perspective of some Chinese people who have always liked to give preferential treatment to foreign masters, it was not certain that these two rootless foreign friends would be more valued by this group of leaders, and he would instead become a detestable person who tried to sabotage their plans—if so, his best outcome would be "controlled use."
 
-　　这给他很大的苦恼，他深知领导人物的想法往往会与众不同，而且这种古怪的思维模式是伴随着职位而不是个人——一个人成为了领导，想事情的方式和逻辑就会与众不同，其他人很难揣摩他的真实意图。在他看来，这个时空冒险团体的领导也不会例外。
+This gave him a lot of trouble. He knew very well that the ideas of leaders were often different from others, and this strange mode of thinking was associated with the position rather than the individual—once a person became a leader, the way he thought and his logic would be different from others, and it was difficult for others to guess his true intentions. In his opinion, the leaders of this time-space adventure group would be no exception.
 
-　　自从被分配到基本劳动力小组之后，他就一直的默默无闻的干活。“夹起尾巴做人”这个中国普通人民深刻懂得的道理他自然也明白，但是他也在时时刻刻地等待着机会，等待一个执委会承认他是革命同志的机会。
+Since he was assigned to the basic labor group, he had been working in obscurity. He naturally understood the profound truth that ordinary Chinese people understand, "to live with one's tail between one's legs," but he was also waiting for an opportunity at all times, waiting for an opportunity for the Executive Committee to recognize him as a revolutionary comrade.
 
-　　他没想到这个机会很快就来到了。
+He did not expect this opportunity to come so soon.
 
-　　在穿越者们忘乎所以满腔热情的投入这所新城市的建设的时候，谁都没有意识到，这个巨大的工地并没有充分的设防。登陆以后当地人的望风而逃和在几次小规模冲突中取胜让穿越者志得意满，北美分舵运来的满船军火也让他们的安全感膨胀到了极点——以为壕沟、鹿柴、铁丝网、SKS和探照灯这些就能构成最坚固的堡垒。
+While the transmigrators were engrossed in the enthusiastic construction of this new city, no one realized that this huge construction site was not fully fortified. After landing, the local people fled at the sight of them, and the victories in several small-scale conflicts made the transmigrators complacent. The shipload of arms and ammunition from the North American branch also inflated their sense of security to the extreme—they thought that trenches, abatis, barbed wire, SKS rifles, and searchlights could form the most solid fortress.
 
-　　县城里的探子每天都在远处窥探，小心翼翼的不敢凑得很近。那些被骑着轰鸣怪兽的海贼抓走的同伴已经给了他们足够的教训。最勇敢的人在白天利用树木和草丛，慢慢的靠近，多少能看到海贼们正在忙碌的做什么。城里基本上了解到了海贼们的一举一动，只是束手无策而已。能商量的人本来就不多，但是说来说去都是些纸上谈兵的东西，士绅们又不积极，拿什么去打？他清楚这伙老财们的想法：大不了危急关头往城外的村寨里一躲：小乱避城，大乱避乡，这是千百年来屡试不爽的老话。他身为县令，城破断无自己逃命之理，免不了要来个以身殉城——这他可老大不愿意的——要不是出仕之心甚旺也不会大费周章的大挑到这么个穷乡僻壤来当县令了。
+The spies in the county town were peeking from a distance every day, carefully not daring to get too close. The companions who were captured by the pirates riding roaring monsters had taught them enough lessons. The bravest people used trees and grass during the day to slowly get closer, and could more or less see what the pirates were busy doing. The city basically understood the pirates' every move, but they were helpless. There were not many people to discuss with, but what they said was all armchair strategy. The gentry were not active, so what could they use to fight? He knew the thoughts of this group of old moneybags: at worst, they would hide in the villages outside the city in a critical moment. "In a small chaos, avoid the city; in a great chaos, avoid the countryside." This was an old saying that had been tried and tested for thousands of years. As the county magistrate, if the city fell, there was no reason for him to escape with his life. He would inevitably have to die with the city—he was very unwilling to do this—if it weren't for his strong desire to become an official, he wouldn't have gone to such great lengths to be a county magistrate in such a poor and remote place.
 
-　　城里也不太平，避到县城里的乡民有二千多，城里根本没那么多房子可住，四乡的农民要么躲进了城，没进城的也不敢把粮米和蔬菜运进城，深怕路上被海贼们劫去了。各种食物都很匮乏，避难的人就靠着粥棚的施舍过日子，营养不良加上风餐露宿，老人和孩子因为体弱已经死去了一些，每天街上都有人在哀哭，把个吴县令搞得心神不宁，他深怕一旦风吹草动，民变起来可不得了。为此他每天都亲自带人去巡街，安抚下民心。
+The city was not peaceful either. There were more than two thousand villagers who had fled to the county town, and there were not enough houses in the city to live in. The farmers from the four townships either hid in the city, or those who did not enter the city did not dare to transport grain, rice, and vegetables into the city, for fear of being robbed by the pirates on the way. All kinds of food were scarce. The refugees lived on the charity of the porridge sheds. Malnutrition, coupled with sleeping in the open, had already caused some of the elderly and children to die due to their weak bodies. Every day, there were people crying in the streets, which made Magistrate Wu feel uneasy. He was deeply afraid that once there was any trouble, a civil unrest would be terrible. For this reason, he personally led people to patrol the streets every day to appease the people.
 
-　　防着万一，他已经派遣亲信家人带着丁壮，把自己的家人和贵重积蓄都秘密送到了府城，关照一旦出了什么闪失，立刻送他们渡海回乡去。这样他就成了彻底的“裸身当官”了。
+Just in case, he had already sent his trusted family members with able-bodied men to secretly send his family and valuable savings to the prefectural city, with instructions to immediately send them across the sea back to their hometown if anything went wrong. In this way, he became a complete "naked official."
 
-　　城里胆战心惊的熬了十多天，海贼们还是没有来攻打的动静，探子们回来报，髡贼们把路修到了百仞滩后就停了下来，眼下正在那里大兴土木，似乎并无攻城的意思。吴明晋想不通百仞滩那地方有什么特别之处值得他们挖来挖去的——没听说此地有什么古墓或是财宝埋藏的传说。
+The city spent more than ten days in fear, but the pirates still did not come to attack. The spies came back and reported that the髡贼 (kun zei - cut-hair bandits) had stopped after building the road to Bairen Tan, and were now engaged in large-scale construction there, seemingly with no intention of attacking the city. Wu Mingjin couldn't figure out what was so special about Bairen Tan that was worth them digging around—he had never heard of any ancient tombs or treasures buried there.
 
-　　“这倒是伤脑筋啊。”吴明晋拍了下自己的脑袋，这十来天，似乎头发都白了不少。
+"This is really a headache." Wu Mingjin patted his head. In the past ten days, it seemed that his hair had turned a lot grayer.
 
-　　“老爷，符巡检求见。”长随进来禀报。
+"My lord, Inspector Fu requests an audience." The long-serving attendant came in to report.
 
-　　“请他进来。”吴明晋没有好气的说，虽说他知道符柏文的十二个人本来就抵挡不了髡贼们的登陆，但是他对此人的望风而逃，没有力战还是心存芥蒂的。眼下又只能敷衍他，毕竟是本县唯一的武官，还要有所依仗。符柏文大概也自知道罪责重大，无论是城里备战还是出城探查都很卖力。
+"Let him in." Wu Mingjin said irritably. Although he knew that Fu Baiwen's twelve men could not have stopped the髡贼 (kun zei - cut-hair bandits) from landing, he still held a grudge against this person for fleeing at the sight of the enemy and not fighting hard. Now he could only be perfunctory with him. After all, he was the only military officer in the county, and he still had to rely on him. Fu Baiwen probably also knew that his crime was serious, and he was very diligent in both preparing for war in the city and scouting outside the city.
 
-　　“堂翁，髡贼们在百仞滩上筑城了！”
+"Your Honor, the髡贼 (kun zei - cut-hair bandits) are building a city on Bairen Tan!"
 
-　　吴明晋的手一抖，茶水都泼出了，他忙问：“如何知晓？”
+Wu Mingjin's hand trembled, and the tea spilled. He hurriedly asked, "How do you know?"
 
-　　“昨日我亲自去探查，髡贼们已经在百仞滩上盖起了许多房屋了！”
+"Yesterday I went to investigate in person. The髡贼 (kun zei - cut-hair bandits) have already built many houses on Bairen Tan!"
 
-　　吴明晋的茶盏都险些掉在地上——他最担心的事情就是这个，海贼盘踞不去的话，他如何是好？过去他还总抱有希望，海贼们呆些日子自然就走了，现在他们非但不走，还在修路，现在又在离县城不到十里地的地方修寨子了。
+Wu Mingjin's teacup almost fell to the ground—this was what he was most worried about. If the pirates stayed, what would he do? In the past, he had always hoped that the pirates would leave after a few days. Now, not only did they not leave, they were also building roads, and now they were building a stockade less than ten li from the county town.
 
-　　一旦寨子修成，海贼们就会长期盘踞下来，别得不说，现在已交九月，马上就是征秋粮的日子，文澜河两岸又是本县的粮米产地，海贼们就在眼前，老百姓哪还敢去下地收粮！
+Once the stockade was built, the pirates would be entrenched for a long time. Not to mention, it was already September, and it was time to collect the autumn grain. The banks of the Wenlan River were the county's grain and rice producing areas. With the pirates right in front of them, how would the common people dare to go to the fields to harvest the grain!
 
-　　征不上秋粮……吴大令知道这比境内闹海贼的性质要严重得多，别得不说这乌纱是肯定没戏了。
+If the autumn grain could not be collected... Magistrate Wu knew that this was much more serious than having pirates in the territory. Not to mention, his official career would definitely be over.
 
-　　“快请刘先生。”吴明晋转了个圈子，吩咐道，“把城里的士绅们都请来！还有黄家寨的黄老爷。”
+"Quickly, invite Mr. Liu." Wu Mingjin turned around and ordered, "Invite all the gentry in the city! And Old Master Huang from Huang Family Village."
 
-　　城里的官绅在会议上听了探子们的消息，其中颇有些读过兵书的，见这群髡贼沿着大路一字排开，便自以为海贼不知兵，摆出这首尾不能相顾的一字长蛇阵。没修筑在博铺那里壕垒森沿的寨子。各处背着鸟铳的匪人不过二三个，都是些短衣髡发的工徒在劳作。
+The officials and gentry in the city heard the news from the spies at the meeting. Among them, there were quite a few who had read military books. Seeing this group of髡贼 (kun zei - cut-hair bandits) lined up along the main road, they thought that the pirates did not know military affairs and had set up a long snake formation that could not support its head and tail. They had not built a stockade with deep trenches and high ramparts like the one at Bopu. There were only two or three bandits with matchlocks at each location, and they were all short-clothed,髡发 (kun fa - cut-hair) laborers.
 
-　　这一来，官绅们胆气壮了许多，符柏文因为身为博铺巡检丢失了防地，为了将功折罪对攻打海贼们鼓吹最为积极。吴县令特意指出眼下秋忙将近，沿江各村的农民都不敢下地，一耽搁下来这一年的收成可就没了，不仅上对不起朝廷，下面的小民恐怕也无以为生，更不用说交租子了……士绅们的心思渐渐活了起来，事关自己的切身利益，他们就不得不主动一些了。有人当即就表态愿意出人出钱去打仗，赶走海贼。
+This made the officials and gentry much more courageous. Fu Baiwen, because he had lost his defensive position as the inspector of Bopu, was the most active in advocating for an attack on the pirates in order to redeem himself. Magistrate Wu specially pointed out that the autumn harvest was approaching, and the farmers in the villages along the river did not dare to go to the fields. If there was a delay, the harvest for the whole year would be gone. Not only would he be failing the court, but the common people below would probably have no means of livelihood, let alone pay rent... The gentry's minds gradually became active. Since it concerned their own vital interests, they had to be more proactive. Someone immediately expressed their willingness to contribute men and money to fight the war and drive away the pirates.
 
-　　九月十一这一天，有乡勇的各村寨团总都奉命进城计议，吴大令这次措辞极其严厉，加上本县几个豪绅大户都明确表态愿意死战，小寨子也不得不同意参加，或三人五人，或出刀枪火药的，到十三这天，县城里已经到了乡勇近三百人，吴县令还觉得不够，派人去县南的新化乡黎畔都，向黎峒征发了三十黎人土兵，这些土兵都是弩手，配着毒药炼制过的毒箭。
+On the eleventh day of the ninth month, the militia leaders of all the villages with local braves were ordered to enter the city for a meeting. Magistrate Wu's wording this time was extremely severe. In addition, several powerful gentry and large households in the county had clearly stated their willingness to fight to the death. The small stockades also had to agree to participate, either by contributing three or five men, or by providing swords, spears, and gunpowder. By the thirteenth, nearly three hundred local braves had arrived in the county town. Magistrate Wu still felt that it was not enough and sent people to Xinhua Township and Lipan Du in the south of the county to recruit thirty Li native soldiers from the Li villages. These native soldiers were all crossbowmen, equipped with poisoned arrows.
 
-　　刘进士建议夜袭，吴县令也十分赞同。但是符巡检和黄守统都反对，他们有一些实战经验，知道晚上打仗就是训练最好的官军都难以控制队伍进退，更不用说他们这样临时凑集起来的乌合之众了。既然是乌合之众，唯一的办法就依仗人多势众，猛攻海贼一点，来个以众欺寡，吃掉一股人马，毁掉些海匪的车辆器具。
+Jinshi Liu suggested a night attack, and Magistrate Wu also agreed very much. But Inspector Fu and Huang Shoutong both objected. They had some practical combat experience and knew that it was difficult to control the advance and retreat of the troops even for the best-trained official army at night, let alone a motley crew like them that had been hastily assembled. Since it was a motley crew, the only way was to rely on their numerical superiority, attack one point of the pirates fiercely, use the many to bully the few, wipe out a group of men, and destroy some of the pirates' vehicles and equipment.
 
-　　符柏文命众人多备火种火药，准备打仗的时候用来放火，原打算把卫所的佛郎机炮也带去的，孙百户却执意不肯，声称炮和兵都是来守城的，出城打仗是县里的事情，他管不着。吴县令亲自去说，也吃了回票。他心里十分失望，去白沙汤允文处的信使也回来，汤允文称最近要参加围剿刘老香的战斗，没时间来到驱逐这“小股海贼”。
+Fu Baiwen ordered everyone to prepare more kindling and gunpowder to be used for setting fires during the battle. He had originally planned to bring the Franc-gun from the garrison, but Centurion Sun stubbornly refused, claiming that the cannon and soldiers were there to defend the city, and that fighting outside the city was the county's business, and he had no control over it. Magistrate Wu personally went to persuade him, but was also rejected. He was very disappointed in his heart. The messenger who went to Tang Yunwen in Baisha also came back. Tang Yunwen said that he had to participate in the battle to encircle and suppress Liu Laoxiang recently and had no time to come and expel this "small group of sea pirates."
 
-　　不过汤允文如此作答也在他的意料之中，贼人不破临高城，官军就不会来剿匪。眼下只有打点起精神，奋力一搏了。
+However, Tang Yunwen's answer was also within his expectations. If the bandits did not break through Lingao City, the official army would not come to suppress the bandits. Now, he could only brace himself and fight with all his might.
 
-　　县里一面把武库里的东西都搜罗出来装备给这些衣不蔽体的乡勇，又叫城里的铁匠新打造了许多铁枪头，搜罗了各种废铜烂铁做炮子用，征集了人手打造战车……一时间城里闹得鸡飞狗跳喧闹不堪。
+On the one hand, the county gathered all the things in the armory to equip these poorly clothed local braves. On the other hand, they ordered the blacksmiths in the city to forge many new iron spearheads, collected all kinds of scrap copper and iron to make cannonballs, and recruited people to build war chariots... For a time, the city was in a state of chaos and noise.
 
-　　城里的这些动静，一丝不少的都被在城下的观测哨报告到了执委会。到底临高县是在进一步增强防御，还是在准备一次反攻，这个谁也下不了判断。最后加强警戒的命令下了下去，但是军事组实际上已经没有更多力量了。
+All these movements in the city were reported to the Executive Committee by the observation post under the city without a single detail missing. Whether Lingao County was further strengthening its defense or preparing for a counterattack, no one could make a judgment. Finally, the order to strengthen the alert was issued, but the military group actually had no more strength.
 
-　　连登陆后动员的武装民兵在内，军事组总共也只有七十多人，其中还扣除了派往县城外监视点的三个人和护送远程侦察勘探队的二个人，余下的人要负责从博铺营地、沿公路路警戒哨一直到百仞滩工地本身的警卫任务，军事组已经取消了三班倒的执勤方式，采取两班倒，才勉强维持住了一定的警备规模。
+Including the armed militia mobilized after landing, the military group had a total of only more than seventy people. Among them, three people sent to the surveillance point outside the county town and two people escorting the long-range reconnaissance and exploration team were deducted. The remaining people were responsible for the security tasks from the Bopu camp, along the road guard posts, all the way to the Bairen Tan construction site itself. The military group had already canceled the three-shift duty system and adopted a two-shift system to barely maintain a certain scale of security.
 
-　　这样一条满是漏洞的防线在大明的乡勇团练面前有没有效果，只有实战才能回答这个问题。这不是一个游戏，它没有LOAD可用，每死一个人，每损失一件设备，就意味着不可挽回的损失。
+Whether such a defensive line full of loopholes was effective in front of the Ming Dynasty's local braves and militia could only be answered by actual combat. This was not a game, there was no LOAD available. Every person who died, every piece of equipment lost, meant an irretrievable loss.
 
-　　从观测所传来的种种消息都说明，大明临高县即将对他们展开一次全面的进攻。这出乎执委会的预计，原先以为县里在没有得到明军的增援之前是不会进攻的，但是农历九月十三日这天，观察哨发现有人在拆卸城楼上虎尊炮，这个举动进一步证明了军事组的推测。何鸣警告执委会，他们现在的安全形势很不乐观，执委会在紧急会议上决定全面动员，除了少数工程继续进行，其他全部暂停，向所有男性分发SKS步枪，向所有女性分发左轮手枪，并且由军事组的负责尽快进行几次实弹射击训练。
+All kinds of news from the observation post indicated that Daming Lingao County was about to launch a full-scale offensive against them. This was beyond the expectation of the Executive Committee. They had originally thought that the county would not attack without the reinforcement of the Ming army. But on the thirteenth day of the ninth lunar month, the observation post found that someone was dismantling the Tiger Respect Cannon on the city tower. This move further confirmed the military group's speculation. He Ming warned the Executive Committee that their current security situation was not optimistic. The Executive Committee decided in an emergency meeting to fully mobilize. Except for a few projects that would continue, all others would be suspended. SKS rifles would be distributed to all males, and revolvers to all females. The military group would be responsible for conducting several live-fire shooting trainings as soon as possible.
 
-　　何鸣知道多数人受过的训练有限，在穿越准备的阶段因为条件的限制，所谓的军事训练主要是走队列和练体能，实弹射击没搞过几次，一个不熟悉射击的菜鸟拿SKS和拿烧火棍也没什么区别，更不用指望他们能主动有效的战斗了。
+He Ming knew that most people had limited training. During the preparation phase of the transmigration, due to limited conditions, the so-called military training was mainly marching and physical training. There were not many live-fire shooting sessions. A rookie who was not familiar with shooting was no different from holding a fire stick with an SKS, let alone expecting them to fight actively and effectively.
 
-　　军事组经过会议讨论之后，决定继续沿用机动防御的计划，一旦遇到攻击，动员兵们就退守到重要据点里去，军事组的战士则用农用车和吉普进行机动，敌人在哪里集结最大的攻击力量，农用车机动部队就从侧后对其出其不意的进行攻击。何鸣相信己方强大的通讯和机动能力将有力的弥补兵力的不足。
+After a meeting and discussion, the military group decided to continue to use the mobile defense plan. Once attacked, the mobilized soldiers would retreat to important strongholds. The soldiers of the military group would use agricultural vehicles and jeeps for maneuver. Wherever the enemy concentrated their greatest attack force, the agricultural vehicle mobile unit would attack them from the side and rear unexpectedly. He Ming believed that his side's strong communication and mobility would effectively compensate for the lack of troops.
