--- a/_posts/2009-11-18-2-03200.md
+++ b/_posts/2009-11-18-2-03200.md
@@ -1,99 +1,99 @@
 ---
 layout: post
-title: 第三十二节 临高的反攻（二）
+title: Section 32: Lingao's Counterattack (Part 2)
 category: 2
 path: 2009-11-18-2-03200.md
 tag: [normal]
 ---
 
-　　县城里的反攻计划基本上来自刘大霖和黄守统，无形中正好形成了大明常见的以文驭武的局面，刘进士学富五车，又受晚明政治局势的影响，很读了一些兵书，对总体的谋略布划有点心得；黄团总则多年在短兵相接的第一线，小规模的厮杀经历过无数次，战阵指挥进退颇为熟悉。官绅们看到这个局面，都很安心。
+The counter-attack plan in the county town basically came from Liu Dalin and Huang Shoutong. This inadvertently formed the common situation in the Ming Dynasty where the civil officials controlled the military. Jinshi Liu was very learned and, influenced by the political situation of the late Ming Dynasty, had read some military books and had some understanding of overall strategy and planning. Tuanzong Huang, on the other hand, had been on the front line of close combat for many years, had experienced countless small-scale battles, and was quite familiar with commanding troops in battle. The officials and gentry were very relieved to see this situation.
 
-　　从探子们口中得知，海贼们分屯在博铺和百仞滩。探子在百人头滩看到了女人，说明海贼们的老营就在那里，老营即在，中军也该在那里。
+From the spies, they learned that the sea pirates were stationed at Bopu and Bairen Tan. The spies saw women at Bairen Tan, which meant that the pirates' main camp was there. If the main camp was there, the central army should also be there.
 
-　　城里现在聚集的人马虽多，但是能上阵厮杀的有限。黄守统是当地土著，又是多年带勇打仗，哪家的勇能战，哪家的只能欺负老百姓，他心中有数。真正能用的人马也就是他自己带来的一百黄家寨乡勇，还有几家本地大户豪绅的乡勇和家丁，合起来不过二百人。他打算用这些人作为战兵，直接突击海贼们的中枢，最好能一举斩杀几个头目。
+Although there were many people gathered in the city now, the number of those who could fight was limited. Huang Shoutong was a local native and had been leading braves in battle for many years. He knew which family's braves could fight and which could only bully the common people. The real fighting force was the one hundred Huang Family Village local braves he brought with him, as well as the local braves and retainers of a few local powerful gentry families, totaling no more than two hundred people. He planned to use these people as combat troops to directly attack the pirates' central command, preferably to kill a few leaders in one fell swoop.
 
-　　这个策略被某些士绅们置疑：海贼死了头目会不会疯狂的报复？
+This strategy was questioned by some of the gentry: would the pirates retaliate crazily if their leaders were killed?
 
-　　“打仗的事情，切不可心存侥幸，”黄守统捋着亥下的胡须，“动了刀兵就要杀到底，别以为手下留情日后能有退步，到时候别人看你软弱可欺，反而要变本加厉了。”他扫了一眼众人，不怒自威，“把他们打疼了打怕了，他们就会自己滚蛋。”
+"In matters of war, one must not be lucky," Huang Shoutong stroked his beard. "Once the swords are drawn, you must fight to the end. Don't think that showing mercy will give you a way out in the future. At that time, others will see you as weak and easy to bully, and will become even more aggressive." He glanced at the crowd, his expression stern. "If we beat them until they are in pain and afraid, they will run away on their own."
 
-　　当下决定分二路行动，左路以黄家寨的乡勇为主力，带着从城墙上拆下来的二门虎蹲炮，并许多火箭火药罐，一共三百人，由黄守统亲自带队直攻百人头滩；右路由符柏文带队，也有三百多人，不过多数是临时征发的老百姓充当的民壮，多带旗子号角锣鼓，用来造声势佯攻博铺营地作为牵制。为了防着海贼们在城外有探子，两路人马一起出发，做出向博铺进发的样子，半途左路军折返突袭百人头滩。
+It was decided to act in two routes. The left route, with the Huang Family Village local braves as the main force, brought two Tiger Squatting Cannons dismantled from the city wall, as well as many rockets and gunpowder pots, a total of three hundred people, led by Huang Shoutong himself to directly attack Bairen Tan. The right route was led by Fu Baiwen, with more than three hundred people, but most of them were temporarily conscripted common people acting as militia. They carried many flags, horns, gongs, and drums to create a feint attack on the Bopu camp as a diversion. In order to prevent the pirates from having spies outside the city, the two routes set off together, pretending to be heading for Bopu. Halfway, the left route army turned back to launch a surprise attack on Bairen Tan.
 
-　　两路人马约定起火为号，由右路军先攻博铺，随后主力发动攻击，无论哪一路要撤出战斗，就以狼烟为信号。
+The two routes agreed to use fire as a signal. The right route army would attack Bopu first, and then the main force would launch an attack. If either route wanted to withdraw from the battle, they would use wolf smoke as a signal.
 
-　　城里留守的除了衙役，还有二百人。县里的弓手民壮因为欠粮饷太久，吴明晋怕将他们留下守城，一旦失利便会乘机在城内和四乡骚乱抢劫，各村来的乡勇，他也不敢完全信用，便用掺沙子的办法，民壮乡勇弓手卫所兵混合编组着守城。民壮们不想去打仗的只能贿赂典史，没钱被赶去打仗的个个心怀怨言。
+In addition to the yamen runners, there were two hundred people left to guard the city. The county's archers and militia had not been paid for a long time. Wu Mingjin was afraid that if he left them to defend the city, they would take the opportunity to riot and plunder in the city and the four townships in case of a defeat. He also did not fully trust the local braves from the various villages, so he used the method of mixing sand, and the militia, local braves, archers, and garrison soldiers were mixed and organized to defend the city. The militia who did not want to go to war could only bribe the registrar. Those who had no money and were forced to go to war were all full of resentment.
 
-　　九月十六这天，各项准备都已完备，县里在街道上支起锅做饭，许多人是今年第一次吃上干饭，都挤在锅前，个个垂涎欲滴地看着，嗅着。
+On the sixteenth day of the ninth month, all preparations were complete. The county set up pots in the streets to cook rice. Many people were eating dry rice for the first time this year. They all crowded in front of the pots, looking and smelling with drooling mouths.
 
-　　“天爷，可吃到顿饱饭了。”
+"My goodness, I can finally eat a full meal."
 
-　　“本来要吃干饭就得到农忙，这二年连农忙都吃不到了。”
+"Originally, we could only eat dry rice during the busy farming season. In the past two years, we couldn't even eat it during the busy farming season."
 
-　　“天也邪兴，临高这地居然会下霜！”
+"The weather is also strange. It actually frosts in Lingao!"
 
-　　“就怕这顿是断头饭。”
+"I'm just afraid this is our last meal."
 
-　　“别说丧气话，不吉利。”
+"Don't say such unlucky things, it's not auspicious."
 
-　　县丞吴亚带人送了几百贯钱过来，说是开拔的赏钱，又拿了二十套新纳好的棉甲——这种甲物虽然物料易得，但在南海之地穿着未免太热，所以很少有穿用的，这是临时赶制出来。黄守统知道县令是倚自己为长城了，十分感动，再三称谢。决意要力战。
+County Magistrate Wu Ya brought a few hundred strings of cash, saying it was a reward for setting out. He also brought twenty sets of newly made cotton armor—although the materials for this kind of armor were easy to obtain, it was too hot to wear in the South China Sea, so it was rarely used. This was a rush job. Huang Shoutong knew that the county magistrate was relying on him as a great wall, and he was very moved. He thanked him repeatedly and was determined to fight hard.
 
-　　他将自己的二儿子叫了过来，黄守统的二儿子黄禀坤在县学里读书，是个生员，眼见三弟新丧不过几天，父亲又在秣兵砺马，一副决一死战的模样，心中十分不安。
+He called his second son over. Huang Shoutong's second son, Huang Bingkun, was a student in the county school and a shengyuan. Seeing that his third brother had just died a few days ago, and his father was preparing for war, looking like he was determined to fight to the death, he was very uneasy in his heart.
 
-　　“禀坤，为父今天就要去剿贼了，”他抚着自己的膝盖，“海贼厉害，此去并无十分的把握……”
+"Bingkun, your father is going to suppress the bandits today," he stroked his knee. "The sea pirates are powerful, and I am not very confident about this trip..."
 
-　　“父亲——”
+"Father—"
 
-　　“你不要说话，”黄守统沉声道，“为父已经是五十开外的人了，纵有意外，你和你大哥也不必太过悲伤。你大哥虽然武勇，却不爱读书，不如你聪慧。故而我只叮嘱于你：这十多年来天下乱相渐现，我们这里幸好是边鄙小县，然而一旦天下大乱，不免宵小之辈乘机作乱。你们第一是带领子弟执干戈以卫桑梓，第二便是要顺应天命！”他盯着儿子的眼睛，“且不可多读了几本书，就读出个愚忠愚孝来，你可明白？！”
+"Don't speak," Huang Shoutong said in a deep voice. "Your father is already in his fifties. Even if there is an accident, you and your elder brother don't have to be too sad. Although your elder brother is brave, he doesn't like to study and is not as smart as you. Therefore, I only instruct you: in the past ten years, the world has become more and more chaotic. Fortunately, we are in a remote and small county. However, once the world is in great chaos, it is inevitable that some petty people will take the opportunity to cause trouble. Your first task is to lead the disciples to take up arms to defend the homeland, and the second is to obey the will of heaven!" He stared at his son's eyes, "You must not read a few more books and become a foolishly loyal and filial person. Do you understand?!"
 
-　　“是！儿子明白。”黄禀坤心里即明白又胡涂，但不敢多问。
+"Yes! I understand." Huang Bingkun understood and was confused at the same time, but he did not dare to ask more.
 
-　　“一会你随我出城，路上便回黄家寨去。”
+"In a moment, you will follow me out of the city and return to Huang Family Village on the way."
 
-　　“儿子愿随父亲一起去厮杀！”
+"I am willing to go and fight with my father!"
 
-　　“傻小子……”黄守统长叹道，“你是秀才，刀兵凶险，黄家不能没有你！”
+"Silly boy..." Huang Shoutong sighed. "You are a xiucai. The battlefield is dangerous. The Huang family cannot be without you!"
 
-　　“还有大哥——”
+"And elder brother—"
 
-　　“你大哥是个白身，”黄老爷子在家丁的帮助下穿上棉甲，“吴太爷总是要调走的，将来新来得太爷能记得咱爷们的血汗功劳？有个秀才，说话都响亮点。”
+"Your elder brother is a commoner," Old Master Huang put on his cotton armor with the help of his retainers. "Magistrate Wu will always be transferred. Will the new magistrate in the future remember our sweat and blood? With a xiucai, our words will carry more weight."
 
-　　他听了，这才深悟父亲的苦心，只是心中又隐隐的觉得不甘。
+After hearing this, he finally understood his father's painstaking efforts, but he still felt a little unwilling in his heart.
 
-　　黄守统嘱咐了儿子这才领着大队人马出城。一路上在路上，他一方面为这次吴县令的信任所感动，一方面心头上总是摆脱不掉一种不好的预感：这股乘着巨大的铁船，驱使着人力不能抗衡的机械的海贼并不是他一直打交道的土匪强盗，他们的到来或许意味着许多事情将会彻底的改变。他抬眼望天，天空只有淡淡浮云，却让他觉得日色昏昏无光，这大明的天下，真得要有大变了么？
+After instructing his son, Huang Shoutong led the large group of men out of the city. On the way, he was moved by Magistrate Wu's trust this time, but at the same time, he could not get rid of a bad premonition in his heart: this group of sea pirates who rode on huge iron ships and drove machinery that could not be resisted by human power were not the bandits and robbers he had always dealt with. Their arrival might mean that many things would change completely. He looked up at the sky. There were only faint floating clouds in the sky, but it made him feel that the sun was dim and without light. Was this world of the Ming Dynasty really going to undergo a great change?
 
-　　从路上分兵出来，他先把队伍带到离开百仞滩二里的地方，一面等候博铺的佯攻开始，一面听探子的回报。他打定主意，若是百人头滩此刻无备，即使符柏文那里没有开始他也要提前进攻。
+After splitting up on the road, he first led the team to a place two li away from Bairen Tan. On the one hand, he waited for the feint attack on Bopu to begin, and on the other hand, he listened to the reports of the spies. He had made up his mind that if Bairen Tan was unprepared at this moment, he would attack in advance even if Fu Baiwen had not started there.
 
-　　不多会，探子回报说百人头滩的海贼都收缩回各个营地去了，外面已经没有人走动。黄守统点了点头，这点并没出乎他的意外，对方的探子大概早就侦知了他们的动向了。
+After a while, the spies reported that the pirates at Bairen Tan had all shrunk back to their respective camps, and there was no one moving outside. Huang Shoutong nodded. This was not beyond his expectation. The other side's spies had probably already detected their movements.
 
-　　又等了片刻，忽然看到博铺方向有烟火的信号，知道符柏文已经开始进攻，他策马走上一个土丘
+After waiting for a while longer, he suddenly saw a signal of smoke and fire in the direction of Bopu. He knew that Fu Baiwen had already begun to attack. He rode his horse up a small hill.
 
-　　“各位父老，我们就要攻向敌阵了。我与诸位都是本地土著，世世代代居于此地，这里有我们田地房屋，祖宗的坟墓祠堂……”说到这里他的觉得自己的眼泪出来了，“今日正是我们护卫乡梓，报效朝廷的日子，大家随我来呀！”
+"Fellow villagers, we are about to attack the enemy's position. I and all of you are local natives, and have lived here for generations. Here are our fields, houses, and the tombs and ancestral halls of our ancestors..." At this point, he felt tears welling up in his eyes. "Today is the day for us to protect our homeland and repay the court. Everyone, follow me!"
 
-　　说完以后，他把马的镫子一磕，带着自己的骑马家丁作为前锋，向百仞滩的方向奔去。乡勇们分成两路，紧随着这十多骑冲来。炮手们十来人一组，前拉后推，拼着命的把两门虎蹲炮推到前面去。
+After speaking, he kicked the stirrups of his horse and, with his mounted retainers as the vanguard, galloped towards Bairen Tan. The local braves were divided into two groups and followed closely behind the dozen or so cavalry. The gunners, in groups of ten, pulled and pushed, desperately pushing the two Tiger Squatting Cannons to the front.
 
-　　何鸣在行政区的警戒塔上用望远镜已经看到了他们的集结，此刻看到方烟尘蔽天，鼓声阵阵传来，知道攻击已经开始了，忙拿起对讲机告警，几乎同时，百仞滩上尖锐的警报声响彻云霄，所有人都是一凛——进攻开始了！
+He Ming had already seen their assembly with binoculars from the watchtower in the administrative area. At this moment, seeing the dust and smoke obscuring the sky and the sound of drums coming in waves, he knew that the attack had begun. He hurriedly picked up the walkie-talkie to give a warning. Almost at the same time, a sharp alarm sounded through the sky over Bairen Tan. Everyone was startled—the attack had begun!
 
-　　“何组长……组长……”来人是通讯组的一个人，此刻连说话都不清了，“博铺告急了！敌人在围攻博铺！”
+"Team Leader He... Team Leader..." The person who came was from the communications team. At this moment, he couldn't even speak clearly. "Bopu is in danger! The enemy is besieging Bopu!"
 
-　　何鸣眉头一皱，从观测哨一路的跟踪报告他就知道敌人是兵分两路的，显然其中有一路肯定是佯攻。但是两路人数都差不多，也都带着许多手推车，现在又几乎同时发动了进攻……
+He Ming frowned. From the tracking reports of the observation post, he knew that the enemy was divided into two routes. Obviously, one of them must be a feint. But the number of people in the two routes was about the same, and they all carried many wheelbarrows. Now they had launched an attack almost at the same time...
 
-　　“让博铺坚持住！”博铺在设防上比百仞滩完善的多，现在又有包括十名军事组组员在内的一百多人守卫，他觉得守住问题不大。
+"Tell Bopu to hold on!" Bopu was much better fortified than Bairen Tan. Now there were more than a hundred people guarding it, including ten members of the military group. He felt that it was not a big problem to hold on.
 
-　　反倒是这个中枢之地，因为建设摊子铺开了，要保卫的地方很多，住宅区要保卫、堆放器材车辆的地方要保卫、水电站要保卫，刚刚建好的行政区也得保卫。多数地方都只有二道铁丝网和一道土垒。这些没打过几发子弹的城市宅男们有多少战力还是个未知数。
+On the contrary, this central place, because the construction was spread out, had many places to defend. The residential area had to be defended, the place where equipment and vehicles were stored had to be defended, the hydropower station had to be defended, and the newly built administrative area also had to be defended. Most places only had two barbed wire fences and one earthen rampart. The combat effectiveness of these urban otaku who had not fired many shots was still an unknown.
 
-　　黄守统的人马冲到壕沟边，把准备好的土包柴捆丢进去，顷刻就铺出了一条道路，这时候枪声响了，他身边立刻就倒下去了十来个人，海贼的火器好犀利！他伏下身子，纵马快跑，枪声连绵不绝，身边的人不断倒下，他圈转马头，决定不向纵深的贼人老营攻击，而是集中兵力进攻最近的一个营地。他手中大刀一指：
+Huang Shoutong's men rushed to the edge of the trench and threw in the prepared earth bags and bundles of firewood, instantly paving a road. At this time, the gunshots rang out, and a dozen people around him immediately fell. The pirates' firearms were so sharp! He bent down, spurred his horse to run fast, the gunshots were continuous, and people around him kept falling. He turned his horse's head and decided not to attack the deep-seated pirate camp, but to concentrate his forces on attacking the nearest camp. He pointed with his broadsword:
 
-　　“兄弟们，冲杀过去！”
+"Brothers, charge!"
 
-　　被他选中的营地恰好就是行政区，这里因为新近完工不久，连铁丝网都昨天刚支好的。由五十个人守卫着，其中十个是军事组的组员。
+The camp he chose happened to be the administrative area. Because it had just been completed recently, even the barbed wire fence had just been set up yesterday. It was guarded by fifty people, ten of whom were members of the military group.
 
-　　“孟贤！你负责压顶！”何鸣在对讲机里吼叫着，“打那些骑马的。”
+"Meng Xian! You are in charge of suppression!" He Ming roared in the walkie-talkie, "Shoot the ones on horseback."
 
-　　话音未落，一个挥刀跃马的乡勇随着一声枪响栽倒在地。
+Before he could finish his words, a local brave who was brandishing a sword and leaping on his horse fell to the ground with a gunshot.
 
-　　“妈的，打得好！”他不由得用出口赞了一声。这个在体校练过几年移动靶的金融财会专业学生枪法真不错。
+"Damn, good shot!" he couldn't help but praise. This finance and accounting student who had practiced moving targets at the sports school for several years had really good marksmanship.
 
-　　此时乡勇们已经向浪潮一样的涌了过来。枪声乱成了一团。铁丝网后面的人见这些人个个龇牙咧嘴的吼叫挥舞着各式各样的武器冲杀过来，多数人过去都是良民百姓，别说开枪杀人，就是打群架也没看过几次，哪里见过这样的场面，一个个慌乱得目瞪口呆，开了一枪之后就都傻眼了，只凌乱的响了几声枪。
+At this time, the local braves had already surged over like a tide. The gunshots were in a mess. The people behind the barbed wire fence saw these people baring their teeth and roaring, brandishing all kinds of weapons and charging over. Most of them were good citizens in the past. Let alone shooting and killing people, they had not even seen a group fight a few times. How could they have seen such a scene? They were all stunned and dumbfounded. After firing one shot, they were all dumbfounded, and only a few scattered shots were fired.
 
-　　“射击！你们这群蠢货！”何鸣猛得抄起SKS步枪，用力一甩把刺刀甩了出来，飞快的赶到前面，踢打着他们。
+"Fire! You bunch of idiots!" He Ming suddenly picked up his SKS rifle, swung it hard to extend the bayonet, and rushed to the front, kicking and hitting them.
 
-　　终于排枪响了起来，冲锋的灰色浪潮停滞了一下，又跟着涌了过来，这时其他营地也响起了凌乱的枪声来支援他们，大多数穿越者对射击不熟悉，许多人忘记调整表尺就开枪了，还有人抠着扳机一个劲的乱放，很快子弹就打完了。
+Finally, a volley of shots rang out. The gray tide of the charge stagnated for a moment, and then surged over again. At this time, scattered gunshots also came from other camps to support them. Most of the transmigrators were not familiar with shooting. Many people forgot to adjust the rear sight before firing, and some people kept pulling the trigger and firing randomly, and soon ran out of bullets.
