--- a/_posts/2009-11-20-2-03400.md
+++ b/_posts/2009-11-20-2-03400.md
@@ -1,94 +1,94 @@
 ---
 layout: post
-title: 第三十四节 战后（一）
+title: Section 34: Aftermath (Part 1)
 category: 2
 path: 2009-11-20-2-03400.md
 tag: [normal]
 ---
 
-　　[王洛宾][y003]从行政区走出来的时候，心还在狂跳个不停，为了镇定自己，他始终拖着自己的步枪。今天真是好险！一直忙于工地上建设，身体疲惫不堪的时候，敌人这么快就来了！
+When [Wang Luobin][y003] walked out of the administrative area, his heart was still pounding. To calm himself down, he kept dragging his rifle. Today was really dangerous! He had been busy with construction on the site, and his body was exhausted when the enemy came so quickly!
 
-　　在战斗中虽然打掉了一个弹夹，但是到底打中了什么自己也闹不清，30发子弹居然一会就打光了，眼看着敌人就要爬上土垒了，来不及装弹夹了——他一慌就可耻地跑了。整个过程就好像早晨做得梦，混乱而片断，反正神志清醒的时候敌人已经退了。他自己也从战线的一面到了另外一面。好在只有一点擦伤……不知自己今后还能不能活下去呢……
+Although he had fired a full magazine during the battle, he didn't know what he had hit. He had fired all 30 rounds in a short time, and seeing that the enemy was about to climb over the earthen rampart, he didn't have time to reload—he panicked and shamefully ran away. The whole process was like a dream he had in the morning, chaotic and fragmented. Anyway, when he was clear-headed, the enemy had already retreated. He himself had also moved from one side of the front line to the other. Fortunately, he only had a few scratches... He didn't know if he could survive in the future...
 
-　　地上到处是凌乱的弹壳，有的还在冒烟——浪费啊，短时间内穿越众还做不出弹壳，应该及时组织人都捡起来。
+The ground was littered with messy shell casings, some of which were still smoking—what a waste. The transmigrators couldn't make shell casings in a short time. They should organize people to pick them up in time.
 
-　　正想着，看见[萧子山][y001]站在土垒上，满脸厌恶地看着满地的尸体。
+As he was thinking, he saw [Xiao Zishan][y001] standing on the earthen rampart, looking at the corpses on the ground with a disgusted expression.
 
-　　“[子山][y001]，你怎么过来了？”他问。
+"[Zishan][y001], why are you here?" he asked.
 
-　　“这不安排料理后事么”[萧子山][y001]想勉强挤出一个坦然的笑容，但是还是露出了欲呕的神情，“说真得我最怕见死人了……”
+"Aren't we arranging the funeral arrangements?" [Xiao Zishan][y001] tried to force a calm smile, but he still showed a look of wanting to vomit. "To be honest, I'm most afraid of seeing dead people..."
 
-　　“没人喜欢吧。”[王洛宾][y003]也尽量不去看那些死状千奇百怪的尸体，显然即使是子弹打死的人，也并不像电影里那样只是在人身体上优雅的留下一个小孔，象征性的淌一摊血，而是毫不客气的翻出一堆血肉，流淌出大量的鲜血，把土地染得紫黑紫黑的——没亲眼看到很难想像人有这么多的血……
+"No one likes it, right?" [Wang Luobin][y003] also tried his best not to look at the corpses with all kinds of strange death postures. Obviously, even people killed by bullets did not just have a small hole elegantly left on their bodies and a symbolic pool of blood as in the movies, but unceremoniously turned out a pile of flesh and blood, and a large amount of blood flowed out, dyeing the land purple-black—it was hard to imagine that people had so much blood without seeing it with one's own eyes...
 
-　　不远处的一具尸体歪在地上，少了半个脑壳，露着白花花红澄澄的东西，身上棉甲被好几发子弹打了个稀巴烂，被血染红的破碎的棉絮在风中颤动。[王洛宾][y003]赶紧把头扭了过去。由俘虏们临时组织起来的收尸队，用着带来的准备拉掉铁丝网的钩连枪，拽着尸体，往外拉，一具具的都抛在手推车上，一车一车的拉到远处去掩埋。
+A corpse not far away was lying crookedly on the ground, with half of its skull missing, exposing white and red things. The cotton armor on its body was riddled with several bullets, and the blood-stained broken cotton wadding trembled in the wind. [Wang Luobin][y003] quickly turned his head away. The temporarily organized corpse collection team, using the grappling hooks they had brought to pull down the barbed wire fence, dragged the corpses out, threw them one by one onto the wheelbarrows, and pulled them to a distant place to be buried.
 
-　　看着这些俘虏，脸色麻木的抬着拖着尸体，穿越众们的阴沉地看着，“革命不是请客吃饭，不是做文章”，在过去只当是笑话说的一句歌词，在此时此地让他们充分了解了其中的阴冷，革命就是流血和牺牲。革命，无论如何的顺应天道合乎民心，最后死得最多的还是普普通通的百姓。
+Looking at these captives, with numb faces, carrying and dragging the corpses, the transmigrators watched with gloomy faces. "Revolution is not a dinner party, not writing an essay." In the past, this was just a line from a song that was said as a joke. At this time and place, it made them fully understand the coldness in it. Revolution is bloodshed and sacrifice. Revolution, no matter how it conforms to the will of heaven and the hearts of the people, in the end, the ones who die the most are the ordinary people.
 
-　　“对了，[王工][y003]，晚上7点执委会要开扩大会议。”
+"By the way, [Engineer Wang][y003], the Executive Committee will hold an enlarged meeting at 7 pm."
 
-　　“扩大会议？”
+"Enlarged meeting?"
 
-　　“对，是战后的检讨会。除了执委，还有各个专业组的组长和一些骨干，对了，群众代表也要参加。”
+"Yes, it's a post-war review meeting. In addition to the executive committee members, there are also the leaders of various professional groups and some key members. By the way, representatives of the masses will also participate."
 
-　　“群众代表？”
+"Representatives of the masses?"
 
-　　“嗯。”[萧子山][y001]冷着脸，“我看晚上多半会有第一次路线斗争了。”
+"Yes." [Xiao Zishan][y001] said with a cold face, "I think there will probably be the first line struggle tonight."
 
-　　“什么？我们不是打得不错。”在[王工][y003]看来这次战斗虽然有点狼狈，但是战果还是很不错的，而且己方的损失微乎其微。
+"What? Didn't we fight well?" In [Engineer Wang][y003]'s opinion, although this battle was a bit embarrassing, the results were still very good, and their own losses were minimal.
 
-　　“事情要分两面看，”[萧子山][y001]看了看周围，压低了声音，“我们有这么大的技术优势，武器比他们先进几百年，居然被明军突进基地来打，这算不算失误？”
+"Things have to be looked at from two sides," [Xiao Zishan][y001] looked around and lowered his voice. "We have such a great technological advantage, and our weapons are hundreds of years more advanced than theirs, but we were actually broken into the base by the Ming army. Isn't this a mistake?"
 
-　　“的确……”
+"Indeed..."
 
-　　“这里离开敌人的据点才四公里，执委会对近在咫尺的威胁视而不见，只派三个人去监视，算不算轻敌？”
+"This place is only four kilometers away from the enemy's stronghold. The Executive Committee turned a blind eye to the imminent threat and only sent three people to monitor. Isn't this underestimating the enemy?"
 
-　　“嗯，嗯。”[王洛宾][y003]连连点头。
+"Yes, yes." [Wang Luobin][y003] nodded repeatedly.
 
-　　“发现敌人出城，不组织兵力去主动袭扰攻击，坐等他们来围攻，这是什么行为？”
+"When we found that the enemy had left the city, we didn't organize troops to actively harass and attack them, but sat and waited for them to besiege us. What kind of behavior is this?"
 
-　　[王洛宾][y003]冷汗直冒：“[子山][y001]，你这是欲加之罪啊。”
+[Wang Luobin][y003] broke out in a cold sweat: "[Zishan][y001], you are trying to frame someone."
 
-　　[萧子山][y001]摇了下脑袋：“我们登陆以后，一直奉行的是稳健的建设流，竭力避免和明代土著的正面冲突，但是现在看起来，激进线路就要上台了。”
+[Xiao Zishan][y001] shook his head: "After we landed, we have always pursued a steady construction flow and tried our best to avoid direct conflict with the natives of the Ming Dynasty. But now it seems that the radical line is about to come to power."
 
-　　“不可能的，执委会里的基本想法都是一致的。”
+"Impossible, the basic ideas in the Executive Committee are all the same."
 
-　　“领导班子一团和气是正常的。所以要开扩大会议。”[萧子山][y001]阴沉着脸，“专业组长、技术骨干，还有群众代表怎么想，你都知道？”
+"It's normal for the leading group to be in harmony. That's why we are holding an enlarged meeting." [Xiao Zishan][y001] said with a gloomy face, "Do you know what the professional group leaders, technical backbones, and representatives of the masses think?"
 
-　　[王洛宾][y003]想了下，说：“不管大家怎么说，我都坚持稳健作风，坚决支持[文总][y002]的思路。”他忽然笑了起来，拍了下[萧子山][y001]的肩膀，“你太阴谋论了，事事都往政治斗争上想……”
+[Wang Luobin][y003] thought for a moment and said, "No matter what everyone says, I will stick to a steady style and firmly support [Wen Zong][y002]'s ideas." He suddenly laughed and patted [Xiao Zishan][y001]'s shoulder, "You are too much of a conspiracy theorist, you always think of everything in terms of political struggle..."
 
-　　[萧子山][y001]和[王洛宾][y003]在鬼鬼祟祟的扯淡的时候，医务组的人正在帐篷里忙个不停，惨叫声此起彼伏，因为舍不得用麻药，绝大多数伤员都是在清醒的状态下清洗伤口，取出异物，有的上点药就好，有的还得缝合起来。
+While [Xiao Zishan][y001] and [Wang Luobin][y003] were talking nonsense in a sneaky way, the people in the medical team were busy in the tent. The sound of screams was one after another. Because they were reluctant to use anesthetics, most of the wounded had their wounds cleaned and foreign objects removed while they were conscious. Some were fine with a little medicine, while others had to be stitched up.
 
-　　多数人伤得很轻，但是有不少人是伤在脸上，所以看上去满脸是血特别吓人，很多人抬进来的时候处于晕厥状态，把医生们吓得够呛，但是仔细一检查，都是因为紧张害怕造成的，没人是因为失血过多。大夫们用自配的生理盐水清洗伤口，然后用酒精消毒，去掉各种异物，缝合伤口。
+Most people were lightly injured, but many were injured in the face, so they looked particularly scary with their faces covered in blood. Many people were in a faint when they were carried in, which scared the doctors enough. But after a careful examination, it was all caused by tension and fear, and no one was due to excessive blood loss. The doctors used self-made saline to clean the wounds, then disinfected them with alcohol, removed all kinds of foreign objects, and sutured the wounds.
 
-　　这个时空的细菌没什么耐药性，所以只用磺胺软膏做抗感染处理了。有些人还得注射破伤风针。
+The bacteria in this time and space had no drug resistance, so they only used sulfanilamide ointment for anti-infection treatment. Some people also had to be injected with tetanus shots.
 
-　　“好了，你的铁沙都拿掉了。”兰大夫安慰着一个可怜的家伙，他花了一个多小时，从他脸上逐一拔掉20个小碎片，有的看上去是破碎的钱币，另外有些东西很难知道原来到底是什么东西。
+"Okay, all your iron sand has been removed." Dr. Lan comforted a poor guy. He had spent more than an hour pulling out 20 small fragments from his face one by one. Some looked like broken coins, and it was hard to know what the other things were originally.
 
-　　“我会变成麻子了，医生，你会整容吗？”因为疼痛和害怕不断哭泣的伤员问着。
+"I'm going to have pockmarks. Doctor, do you know how to do plastic surgery?" the wounded man who had been crying constantly because of pain and fear asked.
 
-　　兰大夫想我对你的肠胃或许更熟悉一些，但是眼下为了安抚情绪只好先胡说八道了：“没问题，我还在美容医院干过呢。”
+Dr. Lan thought that I might be more familiar with your stomach, but for now, in order to soothe his emotions, he had to talk nonsense first: "No problem, I've worked in a beauty hospital before."
 
-　　“那我先预约挂个号，你手艺可得高点，我还准备娶公主做老婆，就阿九吧……”这边杨宝贵的老婆张子怡（PS：这是龙套本人的要求，不是我恶趣味）见他有点神志不清，把早已准备好的镇静剂给他注射了进去。这个要娶公主的人昏沉沉的睡着了。
+"Then I'll make an appointment first. Your skills have to be good. I'm still planning to marry a princess, let's say Ah Jiu..." At this point, Yang Baogui's wife, Zhang Ziyi (PS: this is the request of the extra himself, not my bad taste), saw that he was a little delirious and injected him with the sedative that had been prepared long ago. This person who wanted to marry a princess fell into a drowsy sleep.
 
-　　但是也有人伤得十分厉害，有人被打掉了牙齿，腮帮子上穿了个洞，好在医务上有个牙医，也备了做假牙的材料和设备，时袅仁担心有人有较大的颚面缺损性伤口的问题，做修补手术他可不在行，医务组的五个医生，都不是外科专长：他是传染病学的，兰方方是内科肠胃专科的，河马是内科医生，有一点骨科临床经验；杨大夫则谁也不愿意让他看病——他是位兽医。
+But there were also people who were seriously injured. Someone had their teeth knocked out and a hole in their cheek. Fortunately, there was a dentist in the medical team, and they also had the materials and equipment for making dentures. Shi Niaoren was worried that someone might have a large maxillofacial defect wound. He was not good at repair surgery. Of the five doctors in the medical team, none of them specialized in surgery: he was in infectious diseases, Lan Fangfang was in internal medicine and gastroenterology, He Ma was an internist with a little clinical experience in orthopedics; as for Dr. Yang, no one was willing to let him see a doctor—he was a veterinarian.
 
-　　受伤的俘虏挤在医务所门前的地坪上，很少有人哀号的，他们多数一声不吭，默默的流着血，有的在伤口上自己包上了破布，海贼们把他们赶到这里来的时候都很惊惶，看到有人不断的用担架把受伤的海贼抬进去，又有包扎好的海贼被抬出来，他们大概明白了这是要救治他们，都安静下来。
+The wounded captives were crowded on the ground in front of the infirmary. Few of them were wailing. Most of them were silent, bleeding silently. Some had wrapped their wounds with rags. When the pirates drove them here, they were all very frightened. Seeing that someone was constantly carrying the wounded pirates in on stretchers, and the bandaged pirates were being carried out, they probably understood that they were going to be treated, and they all quieted down.
 
-　　至于什么时候才会轮到自己，他们倒一点并不着急，中国人自古至今都是很有耐心的。
+As for when it would be their turn, they were not in a hurry at all. Chinese people have always been very patient since ancient times.
 
-　　符不二也躺在这堆人群里，他在逃跑的时候，只觉得自己被狠推了一把倒在地上，然后左腿就再也用不上力了，直到被海贼们用装在鸟铳上的剑逼着爬起来，一撅一拐地走到这里，因为拼了命的跑过，他觉得很累，口很渴，差点跌倒了，他知道不能跌倒，跌倒就会被直接丢在路边重伤的人那里，到了那里，就再也起不来了。幸好他看到本村他的一个长工林二受了点伤也在队伍里，忙求着他扶着自己，才走到这里。
+Fu Buer was also lying in this crowd. When he was running away, he only felt that he was pushed hard and fell to the ground, and then his left leg could no longer be used. It was not until he was forced to get up by the pirates with swords mounted on their matchlocks and limped here that he felt very tired and thirsty because he had run for his life. He almost fell. He knew that he could not fall. If he fell, he would be directly thrown to the side of the seriously wounded on the road. Once there, he would never be able to get up again. Fortunately, he saw that one of his long-term laborers from his village, Lin Er, was also in the team with a minor injury. He hurriedly asked him to help him, and only then did he get here.
 
-　　受伤能走动俘虏都围坐在一起，有海贼拎过来几个铁皮桶，里面装满了清水。这群人走了一路，刚才又是一阵狂奔，这会都渴得厉害，纷纷围上来喝水，场面有点混乱，伤势稍微重一些的，被挤倒在地，痛苦的呻吟着。看守的人赶紧把他们都驱赶开，维持好秩序，让所有人都喝到了水。
+The wounded who could walk were all sitting together. A pirate brought a few iron buckets filled with clean water. This group of people had walked all the way, and had just run wildly. They were all very thirsty now, and they all crowded around to drink water. The scene was a bit chaotic. Those with slightly more serious injuries were pushed to the ground and groaned in pain. The guards quickly drove them away, maintained order, and let everyone drink water.
 
-　　符不二喝了水，又躺了一会，精神好了些，血似乎是不流了，腿上也不怎么疼了。他后悔自己鬼迷心窍的去跟着黄守统来打海贼，本来自己村里呆得好好的：十来户的佃户，三四个长工。只因为当年黄守统带着乡勇帮他打退过土匪，他心存感激，有听说这股海贼很奇特，想看看眼界才带着五六个人跟着来“剿匪”。黄家寨乡勇的强悍，他见识过得，这次又是跟着大队人马，所以很放心。
+Fu Buer drank some water and lay down for a while. He felt a little better. The bleeding seemed to have stopped, and his leg didn't hurt as much. He regretted that he had been bewitched to follow Huang Shoutong to fight the pirates. He had been staying well in his own village: a dozen or so tenant farmers, three or four long-term laborers. It was only because Huang Shoutong had led the local braves to help him fight off the bandits that year that he was grateful. He had also heard that this group of pirates was very strange, and he wanted to see the world, so he brought five or six people with him to "suppress the bandits." He had seen the strength of the Huang Family Village local braves, and this time he was following a large group of people, so he was very relieved.
 
-　　没想到这次败了，还败得这么惨，前前后后才不过几枝香的功夫就全军溃退了，海贼们的火器也太狠毒了！他没看到黄守统在哪，十有八九是死了——毕竟他是冲在第一个。
+He didn't expect to be defeated this time, and so miserably. It was only a matter of a few incense sticks of time before the whole army was routed. The pirates' firearms were too vicious! He didn't see where Huang Shoutong was. He was probably dead—after all, he was the first to charge.
 
-　　远处还躺着是十来个人，都是受了重伤的，他们连哀号的力气都没有了，只是在哼哼唧唧的呻吟，符不二知道这些人是没救了，过会不是过来补刀给个了断，就是直接拉去和死人一起埋了。他不由得打了个冷战。
+There were still a dozen or so people lying in the distance, all seriously injured. They didn't even have the strength to wail, but were just groaning. Fu Buer knew that these people were hopeless. In a moment, they would either be finished off with a knife, or they would be directly taken away and buried with the dead. He couldn't help but shiver.
 
-　　不过自己的小命，似乎不会有什么问题——既然要给他们治伤，就不会急着要他们的命。
+However, his own life seemed to be in no danger—since they were going to treat their wounds, they would not be in a hurry to take their lives.
 
-　　“老爷，你说海贼们想把我们怎么样？”长工马蓬小声的问他，他的伤不值一提，逃跑的时候崴了脚——他是推车运沙包的，枪声一响前面的人一倒就跑了，根本没随队往里面冲，要不是不走运伤了脚，估计这会都回家了。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+"Master, what do you think the pirates want to do with us?" the long-term laborer Ma Peng asked him in a low voice. His injury was not worth mentioning. He had sprained his ankle while running away—he was pushing a cart to transport sandbags. As soon as the gunshots rang out, the person in front of him fell and he ran away. He didn't follow the team to charge in at all. If he hadn't been unlucky enough to injure his foot, he would probably be home by now.
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
 [y003]: /characters/y003 "王洛宾"
