--- a/_posts/2009-11-21-2-03500.md
+++ b/_posts/2009-11-21-2-03500.md
@@ -1,87 +1,87 @@
 ---
 layout: post
-title: 第三十五节 战后（二）
+title: Section 35: Aftermath (Part 2)
 category: 2
 path: 2009-11-21-2-03500.md
 tag: [normal]
 ---
 
-　　“总不会要我们的命罢。”
+"They won't take our lives, will they?"
 
-　　“哎，我娘一定要急坏了。”马蓬开始抹眼泪。
+"Oh, my mother must be worried sick." Ma Peng began to wipe his tears.
 
-　　符不二不是滋味，你有老娘，我可有上上下下一家子呢！老婆倒也算了，纳得几个小妾他可舍不得，特别是第三房小妾还是从广州纳来的，虽然年岁大了些，到底是原来院子出身【注：就是高级妓院，当时所谓行院。这里的年岁大些是按照明代人的标准，女人二十七八就算是徐娘半老了】，打扮风流，又会唱小曲，比本地的乡下丫头不知道强过多少，把个符老爷搞得神魂颠倒。
+Fu Buer felt a bit upset. You have a mother, but I have a whole family! My wife is one thing, but he couldn't bear to part with the few concubines he had taken, especially the third one who was from Guangzhou. Although she was a bit older, she was originally from a brothel [Note: a high-class brothel, what was then called a "xingyuan." The "older" here is according to the standards of the Ming Dynasty, where a woman of twenty-seven or twenty-eight was considered to be past her prime]. She was fashionably dressed, could sing little tunes, and was much better than the local country girls. She had completely captivated Master Fu.
 
-　　又想到儿子小，女儿顶不起门户，自己万一回不去了，积攒起来的家产岂不是会给同宗的那些叔伯兄弟们侵吞了？自己被同宗的眼红不是一天二天了。他是越想越后悔，眼看周边看得不紧，只有二个少年海贼看着，便在自己身上乱摸，倒给他摸出了些散碎银两，合计有二两，又怕不够，把自己的镀金银网巾圈也摘了下来——这个估计也能值得二三钱，再看了半天，思量着二两多银子买跑一个人，这个价码估计也够了，这些小喽罗胃口不会太大。
+He also thought that his son was young and his daughter couldn't support the family. If he couldn't go back, wouldn't the family property he had accumulated be embezzled by his uncles and cousins of the same clan? He had been envied by his clansmen for more than a day or two. The more he thought about it, the more he regretted it. Seeing that the surroundings were not tightly guarded, and there were only two young pirates watching, he fumbled around on his body and found some scattered silver, totaling two taels. Fearing that it was not enough, he also took off his gilded silver net scarf ring—this was probably worth two or three qian. After looking at it for a long time, he thought that more than two taels of silver to buy one person's escape was probably enough. The appetite of these small fries would not be too big.
 
-　　符不二鼓起勇气，哆哆嗦嗦的挨到拿着鸟铳的少年海贼身边，把银子凑上去，他会说些广州话，但是显然那少年听不懂，他只好指指自己，又指了下外面，做了个跑路的动作
+Fu Buer mustered up his courage and tremblingly approached the young pirate holding a matchlock. He offered the silver. He could speak some Guangzhou dialect, but it was clear that the young man couldn't understand. He had to point to himself, then to the outside, and make a running motion.
 
-　　那少年却毫不假以颜色，用带剑的鸟铳朝他比划了一下，吓得符不二不敢言声了，但他也不敢把拿银子的手缩回去——算了，反正一会搜过身之后也不会是自己的了，换个照应也好。少年却并不拿他的钱，只示意叫他拿回去，又指了指他的伤腿，指了指边上的大帐篷。符不二知道意思是要他在这里等治伤。
+But the young man showed no expression and gestured at him with the matchlock with a sword attached, which scared Fu Buer into silence. But he didn't dare to withdraw his hand with the silver—forget it, it wouldn't be his after a search anyway, so it was better to exchange it for some care. But the young man did not take his money, but only motioned for him to take it back, then pointed to his injured leg and to the large tent on the side. Fu Buer knew that he was being told to wait here for treatment.
 
-　　一直忙到晚上，医务组才把伤员们都处理完。符不二的腿上被缝了十多针——对医生来说，这个人很运气，子弹穿透了肌肉，没有留在他的身体里也没有打断骨头或者血管。但是对符不二来说则完全是新奇的体验，他第一次知道皮肉还可以象裁缝缝衣服一样缝起来，虽然缝合的时候他叫得死去活来。
+It was not until evening that the medical team finished treating all the wounded. Fu Buer's leg was stitched with more than ten stitches—for the doctor, this person was very lucky. The bullet had penetrated the muscle without staying in his body or breaking any bones or blood vessels. But for Fu Buer, it was a completely new experience. It was the first time he knew that flesh and blood could be sewn up like a tailor sewing clothes, although he screamed his head off during the suturing.
 
-　　三十多个重伤员在等待的时候已经死掉了三分之二，剩下的，医生们看了一遍之后也觉得救治的希望不大：没有血浆，缺少合格的护士，这些人上了手术台也很难活着下来了。
+Two-thirds of the more than thirty seriously wounded had died while waiting. As for the rest, the doctors took a look and felt that there was little hope of saving them: there was no plasma, a lack of qualified nurses, and it would be difficult for these people to survive on the operating table.
 
-　　“让军事组给他们个痛快吧。”河马知道在资材极度宝贵的现在，不大可能再去用有限的医疗资源去救治这些人了。
+"Let the military team give them a quick end." He Ma knew that in the current situation where resources were extremely precious, it was unlikely that the limited medical resources would be used to treat these people.
 
-　　时袅仁沉吟了片刻，说：“算了，死马当活马医吧。他们能从中午支撑到现在，生命力也够强，我们试试看。”
+Shi Niaoren pondered for a moment and said, "Forget it, let's treat a dead horse as a living one. They have been able to hold on from noon until now, their vitality is strong enough. Let's give it a try."
 
-　　“可是没有血浆啊，还得找人献血。要验血……”
+"But there's no plasma, we have to find people to donate blood. We need to test the blood..."
 
-　　“就用生理盐水，”时袅仁下了决心，“麻药也不必了，能不能活下来看他们的运气。”
+"Just use saline," Shi Niaoren made up his mind. "No need for anesthesia either. Whether they can survive depends on their luck."
 
-　　“这……这……”医疗组的人都惊呆了，没有麻药，没有血浆，给这些重伤失血，有些已经昏迷的人做手术，不等于是杀人么？
+"This... this..." The people in the medical team were all stunned. Without anesthesia, without plasma, to operate on these seriously wounded, bleeding, and some already unconscious people, wasn't that tantamount to murder?
 
-　　“不是都说了么，死马当活马医，能不能活就看他们的造化了。”时袅仁还有句话没说出来：与其眼睁睁的看他们死掉，不如死在手术台上还稍微能让自己的心平一点。他还有句更没法说的话，顺便让大家都练练外科。
+"Didn't I say it? Treat a dead horse as a living one. Whether they can live depends on their fate." Shi Niaoren had another sentence that he didn't say: it was better to let them die on the operating table than to watch them die, which would make his heart feel a little better. He had another sentence that he couldn't say: let everyone practice surgery by the way.
 
-　　“来吧，我们动手吧。”随着他的招呼，忙了大半天的医务组又开始忙活起来了，不过医护人员实在不够用，特别是护士，只好让医生给医生帮忙，最后连兽医杨大夫也被叫来了，他刚帮俘虏的三匹马看完伤，又顺便治疗了下它们的马病。
+"Come on, let's get to it." With his call, the medical team, which had been busy for most of the day, started to get busy again. However, there were not enough medical staff, especially nurses, so they had to let the doctors help the doctors. In the end, even the veterinarian, Dr. Yang, was called over. He had just finished treating the three captured horses and had also treated their horse diseases by the way.
 
-　　“老杨，你会给人开刀吗？”
+"Old Yang, can you operate on people?"
 
-　　“我会给马开刀……”杨宝贵开着玩笑，“清创消毒缝合伤口的活给我好了，这个都差不多。对了，要截肢我也可以做。”
+"I can operate on horses..." Yang Baogui joked. "Just give me the work of debridement, disinfection, and suturing of wounds. It's all about the same. By the way, I can also do amputations."
 
-　　“动手吧。”
+"Let's get to it."
 
-　　晚上召开的战后检讨会，各方面根据战斗中暴露出来的实际情况，整理出五个主要问题：
+At the post-war review meeting held in the evening, based on the actual situation exposed in the battle, five main problems were sorted out:
 
-　　一、军事训练不足，战斗意志很差。多数人不仅枪枝掌握不熟练，无效射击过多，在稍有危险的时候就坚持不住，即使在依托工事抵抗的情况下还发生了溃逃。如果发生在野外，很难说会发生什么。
+1. Insufficient military training and poor fighting will. Most people were not only unskilled in handling firearms, but also had too many ineffective shots. They could not hold on when there was a slight danger, and even fled in disarray when resisting from behind fortifications. If it happened in the wild, it was hard to say what would happen.
 
-　　二、组织性极差，除了军事组员尚且能够有效的听从各组组长的指挥进行战斗之外，军事组几乎无法指挥临时组织起来的群众，“乌合之众”，何鸣在总结会上如是说。
+2. Extremely poor organization. Except for the members of the military group who could still effectively follow the command of the group leaders to fight, the military group could hardly command the temporarily organized masses. "A motley crew," He Ming said at the summary meeting.
 
-　　三、防护方面，钢盔＋防刺服的装备被证明是有效的。但是这次战斗暴露出来的问题是防护面积过小，四肢、面部都缺少防护。需要开发进一步的防护产品。
+3. In terms of protection, the equipment of steel helmets + anti-stab vests proved to be effective. But the problem exposed in this battle was that the protection area was too small, and the limbs and face lacked protection. Further protective products need to be developed.
 
-　　四、战略过于拘谨，把自己局限于百仞滩，没有利用己方在火力、通讯和机动力上的优势主动出击，造成被动挨打的局面。
+4. The strategy was too cautious, limiting themselves to Bairen Tan and not taking the initiative to attack by taking advantage of their superiority in firepower, communication, and mobility, resulting in a passive and beaten situation.
 
-　　五、百仞城的设防显然不足，需要加强。
+5. The defense of Bairen City was obviously insufficient and needed to be strengthened.
 
-　　但是会议的焦点却是下一步的战略方针。
+But the focus of the meeting was the next strategic policy.
 
-　　稳健派依然坚持以两点一线为主要活动中心，加强基地的防御，在造成既成事实之后以工业和技术发展为核心，形成完备的城市和工农业体系，用丰富的物质、优越的生活和和先进的技术形成“明灯效应”，吸引当地人加入流通和建设，最后达到“和平演变”的目的。
+The moderates still insisted on taking the two points and one line as the main activity center, strengthening the defense of the base, and after creating a fait accompli, taking industrial and technological development as the core, forming a complete urban and industrial and agricultural system, and using rich materials, superior life, and advanced technology to form a "beacon effect" to attract local people to join the circulation and construction, and finally achieve the goal of "peaceful evolution."
 
-　　激进派则嘲笑稳健派是真正的“乌龟流”，明明己方的实力大过对方三个世纪，却畏敌如虎，只缩在壕沟和铁丝网后面，不敢去争夺主动权。他们提醒对方，如果不主动出击，摧毁当地的大明统治中心，临高的资源就永远不能为我所用，而且这个统治中心将会一次又一次的组织各种各样的敌对活动。
+The radicals, on the other hand, ridiculed the moderates as a true "turtle school." They were clearly three centuries stronger than the other side, but they were as timid as a tiger, only shrinking behind trenches and barbed wire, not daring to fight for the initiative. They reminded the other side that if they did not take the initiative to attack and destroy the local Ming Dynasty ruling center, the resources of Lingao would never be used by them, and this ruling center would organize all kinds of hostile activities again and again.
 
-　　“临高县今天可以发动这样一次两路并进的进攻，明天也许会派出人来搞偷袭，从前他们也搞过。而未来我们肯定会离开基地越走越远，去搜集各种物质，每次都靠军事组来护送吗？”
+"Lingao County can launch such a two-pronged attack today, and maybe tomorrow they will send people to launch a sneak attack. They have done it before. And in the future, we will definitely leave the base and go further and further to collect various materials. Will we rely on the military group to escort us every time?"
 
-　　激进派列举了占领县城的各种好处：首先是可以捕获县城里的大量人力作为劳动力，其次通过缴获的赋役册可以征税征粮，还能获得县库里的大量物资钱粮……
+The radicals listed the various benefits of occupying the county town: first, a large number of people in the county town could be captured as labor; second, taxes and grain could be collected through the captured tax and corvee registers, and a large amount of materials, money, and grain in the county treasury could also be obtained...
 
-　　这些好处使得许多人都开始心动，虽然稳健派举出史料和现实作为武器：告诉他们城里没有多少居民可以给抓来当苦力，从明代的临高县志看，本县一直不怎么富裕，县库里也不会有多少物资粮食。
+These benefits made many people's hearts flutter. Although the moderates used historical materials and reality as weapons: telling them that there were not many residents in the city who could be captured as coolies, and from the Ming Dynasty's Lingao County Annals, this county had never been very rich, and there would not be much material and grain in the county treasury.
 
-　　这时候激进派的代表人物[马千瞩][y005]却意外的提出把这个问题暂时搁置一下，着重解决这次战斗中暴露出来的训练和组织方面的问题。
+At this time, the representative of the radicals, [Ma Qianzhu][y005], unexpectedly proposed to temporarily shelve this issue and focus on solving the problems of training and organization exposed in this battle.
 
-　　训练工作的确是空白：上岸来十几天，每天都在劳作，根本没时间，实弹打靶也只做过一次，每人打五发子弹就把计委心疼的直叫了，五百个人就得二千五百发子弹。穿越众在这次战斗中损失最大的就是他们的子弹消耗，在这次前后不到一小时的战斗里，消耗了差不多三千发子弹，这可真是个可观的数字。而子弹总库存只有一百万发……这种训练和小战斗就用去了这么多子弹，接下来的仗怎么打？什么时候能生产出金属定装子弹呢？
+The training work was indeed a blank: they had been working every day for more than ten days since they came ashore, and there was no time at all. They had only done live-fire target practice once, and each person fired five bullets, which made the Planning Committee's heart ache. Five hundred people would need two thousand five hundred bullets. The biggest loss for the transmigrators in this battle was their ammunition consumption. In this battle that lasted less than an hour, they consumed nearly three thousand rounds of ammunition, which was a considerable number. And the total ammunition stock was only one million rounds... This kind of training and small battle used up so much ammunition, how would they fight the next battle? When would they be able to produce metal-cased cartridges?
 
-　　至于组织性的问题，显然和军训不足有直接的联系。[萧子山][y001]在会议上提出：各个专业组在战斗中都表现得不错，这显然是因为平时一直在一起工作，彼此熟悉的结果。问题主要出自那些每天临时编组的各种所谓“基本劳动力小组”，这种小组建立伊始是固定编制的，实际现状是每天都根据人力资源部门的调配临时组成，结果大家互相之间即不熟悉，又缺少信任感，平时干活没事，遇到危急状况就难以团结在一起。
+As for the problem of organization, it was obviously directly related to the lack of military training. [Xiao Zishan][y001] proposed at the meeting: the various professional groups performed well in the battle, which was obviously the result of working together and being familiar with each other. The problem mainly came from the various so-called "basic labor groups" that were temporarily formed every day. This kind of group was a fixed establishment at the beginning, but the actual situation was that it was temporarily formed every day according to the deployment of the human resources department. As a result, everyone was not familiar with each other and lacked a sense of trust. It was fine to work at ordinary times, but it was difficult to unite in a critical situation.
 
-　　经过讨论，执委会重申了小组的方案：全体穿越者，除了家庭单位之外，单身人士以自由组合为前提，建立起固定的四人小组，每个小组推举一名组长负责，共同参加劳动，住房也尽量安排在同一间宿舍。通过同吃同住同劳动来增进友谊——大学里的宿舍兄弟之间的关系都比较铁的。
+After discussion, the Executive Committee reaffirmed the group plan: all transmigrators, except for family units, would form fixed four-person groups on the premise of free combination. Each group would elect a group leader to be responsible, participate in labor together, and their housing would be arranged in the same dormitory as much as possible. Friendship would be enhanced through eating, living, and working together—the relationship between dormitory brothers in college was relatively strong.
 
-　　每个小组，都配发一支SKS步枪作为小组装备，这样大家平时就有机会用步枪进行练习，即避免了战时才发枪，大家对武器不熟悉，又防止了人手一支步枪，造成军火失控的局面。
+Each group was issued an SKS rifle as group equipment, so that everyone would have the opportunity to practice with the rifle at ordinary times. This would not only avoid the situation where everyone was not familiar with the weapons when they were issued only in wartime, but also prevent the situation where everyone had a rifle, resulting in the loss of control of firearms.
 
-　　以这些小组为基本单位，每周抽出一定的时间进行军事训练，增强彼此之间协同水平。紧接着，北炜又抛出了一个新的训练计划：“狩猎”。
+With these groups as the basic unit, a certain amount of time would be set aside each week for military training to enhance mutual coordination. Immediately after, Bei Wei threw out a new training plan: "Hunting."
 
-　　“每次我们军事组出动5人，再带2—3个普通小组，”他详细解释着方案，“脱离我们现在只沿着文澜河行动的模式，向各个方向的纵深进行侦察，校正地图，清查各种资源——”
+"Each time, our military group will dispatch 5 people, and then bring 2-3 ordinary groups," he explained the plan in detail. "We will break away from our current mode of only acting along the Wenlan River, and conduct reconnaissance in depth in all directions, correct the map, and investigate various resources—"
 
-　　小组在行进的时候将抓捕单个或者小股的行人，必要的时候，对当地的各种武装人员进行袭击，通过战斗来锻炼队伍，以边走边训，比在基地里走队列练打靶要更接近实战。将穿越者的威权散布到全县的各个角落，使老百姓知道他们的到来，散布必要的恐怖。
+When the group was on the move, they would capture single or small groups of pedestrians, and if necessary, attack various local armed personnel to train the team through combat. By training while on the move, it would be closer to actual combat than marching in formation and practicing target shooting at the base. The authority of the transmigrators would be spread to every corner of the county, so that the common people would know of their arrival and spread the necessary terror.
 
-　　这个计划显然带着血淋淋的气味，但是温和派决定不反对，毕竟二十一人受伤的现实在那里摆着，如果要否决这个计划，激进派势必会重新抛出攻打临高县城的提案，以目前的情绪，稳健派并不觉得自己会在投票中取胜。最后稳健派同意这个“狩猎”计划，作为激进派不再提出攻占县城的妥协。
-[y001]: /characters/y001 "萧子山"
+This plan obviously had a bloody smell, but the moderates decided not to oppose it. After all, the reality of twenty-one people being injured was there. If they were to veto this plan, the radicals would inevitably re-propose the proposal to attack Lingao County. With the current sentiment, the moderates did not think they would win in a vote. In the end, the moderates agreed to this "hunting" plan as a compromise for the radicals not to propose occupying the county town again.
+[y001]: /characters/y001 "Xiao Zishan"
 [y005]: /characters/y005 "马千瞩"
