--- a/_posts/2009-11-22-2-03600.md
+++ b/_posts/2009-11-22-2-03600.md
@@ -1,95 +1,95 @@
 ---
 layout: post
-title: 第三十六节 审俘（一）
+title: Section 36: Interrogating the Captives (Part 1)
 category: 2
 path: 2009-11-22-2-03600.md
 tag: [normal]
 ---
 
-　　有人提出要对俘虏进行全面的审讯和甄别，从他们口中尽量得到当地的情况，这比现在执委会只能依靠情报资料组从书本里找讯息有用得多，也快得多。于是冉耀就得到了一个新任务：审俘。
+Someone proposed a comprehensive interrogation and screening of the captives to get as much information about the local situation as possible from them. This was much more useful and faster than the current situation where the Executive Committee could only rely on the intelligence and materials group to find information from books. So Ran Yao got a new task: interrogating the captives.
 
-　　虽然有人提出俘虏的人权问题之类的疑问，但是许多人显然对如何保障当地土著的人权没兴趣，而对如何折磨俘虏有充分的兴趣，冉耀还没想好该怎么审问，就有人主动上来提出了各种刑具和拷打方法。
+Although some people raised questions about the human rights of the captives, many people were obviously not interested in how to protect the human rights of the local natives, but were very interested in how to torture the captives. Before Ran Yao could figure out how to interrogate them, someone took the initiative to propose various instruments of torture and methods of torture.
 
-　　“我是审俘，又不是拍满清十大酷刑。”冉耀哭笑不得，只好一再拒绝这些人的各类热心提议。不过俘虏这么多，治安组自己的事情又多不能都来干这活，想来想去，他只好向执委会申请，把持有临时身份证的二位前同行借调给他。
+"I'm interrogating captives, not filming the Ten Great Tortures of the Manchu Dynasty." Ran Yao didn't know whether to laugh or cry, and had to repeatedly refuse these people's various enthusiastic proposals. However, there were so many captives, and the security group had its own affairs and couldn't do all the work. After thinking about it, he had to apply to the Executive Committee to second the two former colleagues who held temporary ID cards to him.
 
-　　本来打算在战斗中一露身手的小郭，虽然也发了一支步枪，但是因为地点不对，连一枪都没放上，就轮到了一些打扫战场的活。正在郁闷的时候，一纸调令把他调到了治安组。他一阵激动：终于又能干老本行了！
+Little Guo, who had originally planned to show his skills in battle, although he was also issued a rifle, did not even fire a shot because he was in the wrong place, and was assigned to some battlefield cleaning work. While he was feeling depressed, a transfer order transferred him to the security group. He was excited for a moment: he could finally do his old job again!
 
-　　“好了，小郭，从今天起你负责审俘，今晚先把流程和提纲搞好。”冉耀伸了个懒腰，“对了，我们把慕敏也给调来了，你们就男女搭配，干活不累吧。”
+"Okay, Little Guo, from today on you are in charge of interrogating the captives. Get the process and outline ready tonight." Ran Yao stretched. "By the way, we also transferred Mu Min over. You two will be a male-female pair, so the work won't be tiring."
 
-　　“冉组长，这个，她可是有先生的，和我搭配干活，是不是……”小郭委婉的表达着安排的不妥之处。
+"Team Leader Ran, well, she has a husband. Is it appropriate for me to work with her..." Little Guo tactfully expressed the inappropriateness of the arrangement.
 
-　　“你还够封建的，怎么，要我把大洋马给你调来？”冉耀打趣着他，“萨琳娜的身体也差不多好了，不过他们暂时还没有任用。不好办那。”说着他脱下帽子，捋了下头发，“对了，邬德也会配合你工作，他专管俘虏，你手下过过得人就归他接收。”
+"You're quite feudal. What, you want me to transfer the foreign woman to you?" Ran Yao teased him. "Salina's body is almost recovered, but they haven't been appointed yet. It's not easy to handle." As he spoke, he took off his hat and stroked his hair. "By the way, Wu De will also cooperate with your work. He is in charge of the captives. The people you have interrogated will be handed over to him."
 
-　　“没问题，我一定配合好邬队长的工作！”
+"No problem, I will definitely cooperate well with Captain Wu's work!"
 
-　　“不对，你们是互相配合，不是你配合他，”冉耀嘿嘿地笑了起来，拍了下他的肩膀，“小郭同志，你现在虽然还没有正式的编制，但却是我们治安组的少有的专门人才……”
+"No, you are cooperating with each other, not you cooperating with him," Ran Yao chuckled and patted him on the shoulder. "Comrade Little Guo, although you don't have a formal establishment yet, you are a rare specialist in our security group..."
 
-　　郭逸有点晕的从治安组办公室出来，他的办公地点在河边，建筑组正在那里兴建一个俘虏营地，推土机和挖掘机正在轰鸣着工作，河里，是一群赤条条的肉体，俘虏正在洗澡，郭逸对看男人洗澡没什么兴趣，正要转头走开，背后却有人追着跑了过来：
+Guo Yi came out of the security group office a little dizzy. His office was by the river. The construction team was building a captive camp there. The bulldozers and excavators were roaring at work. In the river, there was a group of naked bodies. The captives were taking a bath. Guo Yi had no interest in watching men take a bath. Just as he was about to turn and walk away, someone ran after him from behind:
 
-　　“郭，郭——”来得正是薛子良，他脑袋上顶着一个钢盔，“可找到你了，这二个星期都没看到你。”
+"Guo, Guo—" It was Xue Ziliang. He had a steel helmet on his head. "I finally found you. I haven't seen you for two weeks."
 
-　　“什么事啊？”郭逸稍微离得他远一点，他可不希望有人注意到他和ABC在说话。
+"What's the matter?" Guo Yi moved a little further away from him. He didn't want anyone to notice that he was talking to the ABC.
 
-　　“郭，你帮我找你们，嗯，嗯——领导，是叫领导吧，说说，给我换个工作吧”他愁眉苦脸地看着自己的磨破的手套，“我都开了二星期的拖拉机了。我可是个ATF！专业人员，你们需要的！”
+"Guo, can you help me find your, um, um—leader, is that what you call them? Tell them to change my job." He looked at his worn-out gloves with a sad face. "I've been driving a tractor for two weeks. I'm an ATF! A professional, you need me!"
 
-　　“这个问题我做不了主，”郭逸朝四周张望了一阵，确信没有人在注意他们，“我自己都是拿临时证的，还替你说话？”
+"I can't make the decision on this matter," Guo Yi looked around, making sure that no one was paying attention to them. "I myself have a temporary ID. How can I speak for you?"
 
-　　“上帝，为什么你们说话都是一个口气！”薛子良仰天长啸，“这个我做不了主……这事要研究研究……领导没空……”
+"God, why do you all speak in the same tone!" Xue Ziliang looked up to the sky and roared, "I can't make the decision on this... This matter needs to be studied... The leader is busy..."
 
-　　郭逸本来想一句话就打发了他，赶紧跑路去和邬德、慕敏商量工作的事情，看着这ABC一脸绝望的模样，又有点可怜他了，“薛，你现在要学着做一个中国人，明白吗？做中国人第一得有耐心，”他用手指戳了一下薛子良的胸口，“耐心，懂吗？好好得干你的活，领导什么都知道。”
+Guo Yi had originally wanted to dismiss him with a single sentence and quickly run off to discuss work with Wu De and Mu Min. Seeing the desperate look on this ABC's face, he felt a little sorry for him. "Xue, you have to learn to be a Chinese now, understand? The first thing to be a Chinese is to have patience," he poked Xue Ziliang's chest with his finger. "Patience, understand? Do your job well, the leader knows everything."
 
-　　说完这话他赶紧走了，至于薛子良是不是能明白他的话，那是另外一回事。就现在看起来，领导层似乎更信任他，而不是洋人，所以他不希望自己的形象总和薛子良他们联系在一块。
+After saying this, he quickly left. As for whether Xue Ziliang could understand his words, that was another matter. As it seemed now, the leadership seemed to trust him more than the foreigners, so he didn't want his image to be always associated with Xue Ziliang and the others.
 
-　　俘虏营地设在在河边，用铁丝网临时围出了一个空地，俘虏们自己动手，搭起了窝棚。邬德带着的五个俘虏现在起到了很大的作用，眼见来了更多的同伴，他们马上意识到，自己将会被重用了。因此在整个安排当中，每个人都竭尽所能的在邬德面前表现着自己的凶狠和能干。
+The captive camp was set up by the river. A clearing was temporarily enclosed with barbed wire. The captives built their own sheds. The five captives led by Wu De now played a great role. Seeing that more companions had come, they immediately realized that they would be put to important use. Therefore, in the entire arrangement, everyone did their best to show their ferocity and ability in front of Wu De.
 
-　　审俘地点就在这个临时俘虏营地的外面，搭起了一个帐篷，为了增强恐吓效果，帐篷外放着一个大号的木墩子，上面搁着一柄从某人收藏中找来的中世纪巨型战斧，还特意用医务室里找来的医疗垃圾充分的将其污染——锃光瓦亮的斧子上如今都是血污。虽然这个东西从来没砍过人，但是看过的还是觉得脖子后面凉飕飕的。
+The interrogation site was just outside this temporary captive camp. A tent was set up. In order to enhance the deterrent effect, a large wooden stump was placed outside the tent, on which was placed a medieval giant battle axe found from someone's collection. It was also specially contaminated with medical waste from the infirmary—the shiny axe was now covered in blood. Although this thing had never cut anyone, those who had seen it still felt a chill on the back of their necks.
 
-　　出这个策划的于鄂水本来还想在帐篷外树起一片长枪林，每个枪头上都戳一个死人的脑袋的，但是遭到了大家的一直反对——这玩意的心理刺激也太强了，恐怕第一个受不了的是他们自己。
+Yu E'shui, who came up with this plan, had originally wanted to set up a forest of long spears outside the tent, with a dead person's head on each spearhead, but it was met with unanimous opposition from everyone—the psychological stimulation of this thing was too strong, and they themselves would probably be the first to not be able to stand it.
 
-　　入夜，帐篷通向营地的路两旁点起了熊熊的篝火。神秘恐怖的气氛让对自己命运恐惧不安的俘虏们更加忐忑，当他被带到到门口，看到那血迹斑斑的斧子的时候，几乎立刻就会瘫软下来。
+At night, blazing bonfires were lit on both sides of the road leading from the tent to the camp. The mysterious and terrifying atmosphere made the captives, who were already fearful and uneasy about their fate, even more apprehensive. When he was brought to the entrance and saw the blood-stained axe, he almost immediately collapsed.
 
-　　审问由二个人一起进行，慕敏在审问的时候基本不开口，只做记录，有时候也提示下小郭——轮到审问的经验，在治安和刑侦做过多年工作的女警察自然比小郭这个以请人喝茶为主的人要多得多，不过现在搞个女海贼来审问，对这群明代人似乎有些惊吓过度，只好暂时让她屈居次位了。负责翻译的是俘虏中普通话学得最好的林兴，熊卜佑也在现场监听，免得有时候把意思搞错。
+The interrogation was conducted by two people together. Mu Min basically did not speak during the interrogation, only taking notes, and sometimes reminding Little Guo—in terms of interrogation experience, the female police officer who had worked in public security and criminal investigation for many years was naturally much more experienced than Little Guo, who mainly invited people for tea. However, having a female pirate interrogate them now seemed to be a bit too much of a shock for this group of Ming Dynasty people, so she had to be temporarily relegated to a secondary position. The one responsible for translation was Lin Xing, who had learned Mandarin the best among the captives. Xiong Buyou was also present to monitor, lest the meaning be mistaken sometimes.
 
-　　俘虏姓名、住址、年龄，职业情况、家庭背景之类。内务委员会责成IT组在服务器里做好了俘虏的人事数据库，只需要直接填写到数据库里就可以。
+The captive's name, address, age, occupation, family background, and so on. The Internal Affairs Committee instructed the IT team to create a personnel database of the captives in the server, and they only needed to fill it directly into the database.
 
-　　虽说审问小组营造了足够的恐怖气氛，但是郭逸和慕敏都很快领教了中国农民所固有的狡猾，每个人都说自己的是三代贫农，上无片瓦，下无立锥之地，都上有八十老母，下有八岁幼子。把个郭逸搞得很纳闷——三代贫农出身当年就这么吃香了？
+Although the interrogation team had created a sufficient atmosphere of terror, Guo Yi and Mu Min soon learned the inherent cunning of the Chinese peasants. Everyone said that they were from three generations of poor peasants, with no roof over their heads and no land to stand on. They all had an eighty-year-old mother at home and an eight-year-old child below. This made Guo Yi very puzzled—was being from three generations of poor peasants so popular back then?
 
-　　至于说姓名和住址，乱七八糟的根本无法判断——一百多人居然来自八九十个村子。显然，有许多人在隐瞒自己的真实情况。不少人在被俘的时候在地上乱滚，企图用泥土掩饰自己，但是河水把他们的伪装都剥掉了。
+As for their names and addresses, they were a mess and impossible to judge—more than a hundred people actually came from eighty or ninety villages. Obviously, many people were hiding their true situation. Many people rolled on the ground when they were captured, trying to cover themselves with mud, but the river water washed away their disguise.
 
-　　换作这个时代的其他审问官员，不是无法在这堆张三李四王二麻子里理出头绪，就是要用肉刑拷打来获得真相了，但是对出自现代专政机构的人来说，这都不是问题。临时编造谎言是很容易忘记的。
+If it were other interrogation officials of this era, they would either be unable to sort out this pile of Zhang San, Li Si, and Wang Ermazi, or they would have to use torture to get the truth. But for people from modern dictatorial institutions, this was not a problem. It is easy to forget a lie that is made up on the spot.
 
-　　……
+...
 
-　　“性别？”
+"Gender?"
 
-　　“姓名？”
+"Name?"
 
-　　“你刚才不还说自己叫赵三么，怎么改姓了？到底叫什么？”
+"Didn't you just say your name was Zhao San? Why did you change your surname? What's your real name?"
 
-　　……
+...
 
-　　不管他如何赌咒发誓自己前面没说过自己叫“赵三”，录音笔都会让他哑口无言。这个有如妖术的小东西让许多人在恐惧中开口说了实话。有些人继续他们的谎言，直到再次被揭穿，这个时候他就会被赶到外面，绕着火堆走路，几个人看着他，不许他睡觉用长枪赶着他不断的绕圈走路，直到他自己愿意说实话为止。郭逸知道这种拷问比什么酷刑都要有效，一个意志最坚定的人在连续四次编造谎言被戳穿以后，绕了半夜的圈子倒下去毙命了，给俘虏们一个可怕的警告。
+No matter how he swore that he had not said his name was "Zhao San" before, the recording pen would make him speechless. This magical little thing made many people speak the truth in fear. Some people continued their lies until they were exposed again. At this time, he would be driven outside to walk around the fire. A few people would watch him and not let him sleep, but would drive him to walk in circles with a long spear until he was willing to tell the truth. Guo Yi knew that this kind of torture was more effective than any cruel punishment. A person with the strongest will, after his lies were exposed four times in a row, walked in circles for half the night and then fell down and died, giving the captives a terrible warning.
 
-　　很快所有俘虏就把自己的一切，连同自己所知道的别人的事情全都一五一十的交代出来了。
+Soon, all the captives confessed everything about themselves, as well as everything they knew about others.
 
-　　多数的确都是穷人，当然他们中的许多人并非真穷得这么过分。俘虏中的有三分之一来自一个叫黄家寨的大村寨，这次进攻的头领就是黄家寨的团总黄守统。
+Most of them were indeed poor, but of course, many of them were not so poor. One-third of the captives came from a large village called Huang Family Village. The leader of this attack was Huang Shoutong, the head of the Huang Family Village militia.
 
-　　来自黄家寨的被俘乡勇多数是佃户、长工，有的自己稍微有些地，也佃些黄家的土地，因为当乡勇，所以待遇要比普通佃户长工好一些，佃户可以少缴些粮，长工也能多些工钱。还有的就是黄家的同宗或者亲戚，不是小地主就是自耕农。这次出来打仗，除了县里给了赏钱，黄守统还许诺打胜了就减他们今年的钱粮，死了的抚恤全家。
+Most of the captured local braves from Huang Family Village were tenant farmers and long-term laborers. Some of them had a little land of their own and also rented some of the Huang family's land. Because they were local braves, their treatment was better than that of ordinary tenant farmers and long-term laborers. Tenant farmers could pay less grain, and long-term laborers could also get more wages. There were also some who were of the same clan or relatives of the Huang family, either small landlords or self-cultivating farmers. This time they came out to fight. In addition to the reward given by the county, Huang Shoutong also promised to reduce their money and grain for this year if they won, and to compensate the families of those who died.
 
-　　所以黄家寨乡勇在这次战斗中特别勇敢，死伤也最大，据其中一个小头目说，除了凑数当劳动力的人之外，来进攻的乡勇死了一大半。
+Therefore, the Huang Family Village local braves were particularly brave in this battle, and their casualties were also the greatest. According to one of the small leaders, except for those who were just there to make up the numbers as laborers, more than half of the attacking local braves died.
 
-　　“那黄守统呢？”郭逸赶紧追问。
+"What about Huang Shoutong?" Guo Yi quickly asked.
 
-　　“没看到黄团总，”那头目说，“副爷们一放鸟铳，团总就下马指挥，接着就不见了……”
+"I didn't see Tuanzong Huang," the leader said. "As soon as the masters fired their matchlocks, the Tuanzong got off his horse to command, and then he disappeared..."
 
-　　其他人则五花八门来自什么地方的都有，多数是被主人家派来凑数的长工，有的则是赤贫户，因为“无牵无挂”所以被宗族或者村里送来打仗的——意思就是死了也不打紧的人。不愿意说自己情况的，多半是有点家业的小地主、自耕农和佃户，怕牵连自己家被海贼们抢掠或者勒索。不少穷人因为害怕，也跟着胡编乱造。
+The others came from all sorts of places. Most of them were long-term laborers sent by their masters to make up the numbers. Some were extremely poor, and because they had "no ties," they were sent by their clans or villages to fight—meaning that it didn't matter if they died. Those who were unwilling to talk about their situation were mostly small landlords, self-cultivating farmers, and tenant farmers with some family property, who were afraid of implicating their families and being plundered or extorted by the pirates. Many poor people also made up stories out of fear.
 
-　　从俘虏们口中，他们知道了附近的许多情况，包括村落的分布，村里大概有多少人，哪些是富户地主，哪些村有什么副业或者特产的，都一五一十地说了出来，也有的人说着说着就横了心，说他愿意入伙当海贼，可以带领他们去抄掠本村的富户，只要许他杀掉谁谁谁就行。
+From the captives, they learned a lot about the nearby situation, including the distribution of villages, the approximate number of people in the villages, who were the rich households and landlords, and what sideline businesses or special products some villages had. They told everything they knew. Some people, as they spoke, became determined and said that they were willing to join the pirates and could lead them to plunder the rich households in their own villages, as long as they were allowed to kill so-and-so.
 
-　　审问小组仔细的记录着他提供的情况，有的人说着说着，情不能自抑，嚎啕痛哭起来，林兴听着也跟着流眼泪。
+The interrogation team carefully recorded the information he provided. Some people, as they spoke, could not control their emotions and burst into tears. Lin Xing also shed tears as he listened.
 
-　　“说得都是什么？”郭逸见都是一脸苦大仇深的模样，问熊卜佑。
+"What are they all talking about?" Guo Yi asked Xiong Buyou, seeing that they all had a look of deep hatred.
 
-　　“说起来真惨——”熊卜佑面露同情的神色，摇着头，“这些说愿意入伙的，都是有血仇的。”
+"It's really tragic to talk about—" Xiong Buyou showed a look of sympathy and shook his head. "These people who say they are willing to join us all have blood feuds."
 
-　　“让他们仔细说说，”郭逸忽然来了兴趣，他的脑子里出来了个想法，“一个一个来。”
+"Let them talk in detail," Guo Yi suddenly became interested. An idea came to his mind. "One by one."
