--- a/_posts/2009-11-23-2-03700.md
+++ b/_posts/2009-11-23-2-03700.md
@@ -1,87 +1,87 @@
 ---
 layout: post
-title: 第三十七节 审俘（二）
+title: Section 37: Interrogating the Captives (Part 2)
 category: 2
 path: 2009-11-23-2-03700.md
 tag: [normal]
 ---
 
-　　“小人名叫张兴教，原是个童生。”那人抖抖筛筛地跪在地上，郭逸他们也没把自己那套平等观念加在这些俘虏身上，不平等的威压反而对他们有利。
+"My name is Zhang Xingjiao, and I was originally a tongsheng." The man knelt on the ground, trembling. Guo Yi and the others did not impose their own concept of equality on these captives. The pressure of inequality was actually beneficial to them.
 
-　　“童身？”慕敏眉头一皱，“处男？他练童子功的？”
+"Tongshen?" Mu Min frowned. "A virgin? Does he practice virgin boy kung fu?"
 
-　　熊卜佑差点没笑出来：“是童生，没考中秀才的读书人。”
+Xiong Buyou almost burst out laughing. "It's tongsheng, a scholar who hasn't passed the xiucai examination."
 
-　　大家仔细看这人，虽然破衣烂衫，肤色黝黑，但是仔细看手脚并不粗大，不是个苦出身的汉子。
+Everyone looked at this person carefully. Although his clothes were tattered and his skin was dark, a closer look revealed that his hands and feet were not rough. He was not a man from a poor background.
 
-　　张兴教见他们有些笑意，自嘲地叹了一声：“小人读书不成，让副爷们见笑了。我家本是这里的土著，几代务农，祖上传下来几亩田地。村里有个苟姓的大姓，因为宗里出了几个富户，和衙门里的书办们说得上话，在村里横行霸道。我父亲气不过，就供我读书，指望能中个功名，支撑门户不受他家的欺负。可是小人无用，一直考不上。”
+Seeing their smiles, Zhang Xingjiao sighed self-deprecatingly, "I have not succeeded in my studies, which has made the masters laugh. My family is originally from here. We have been farmers for generations, and our ancestors passed down a few acres of land. There is a large clan with the surname Gou in the village. Because a few rich households emerged from the clan and they could speak to the clerks in the yamen, they acted tyrannically in the village. My father couldn't stand it, so he sent me to study, hoping that I could pass the imperial examination and support the family so that we would not be bullied by them. But I was useless and failed the examination again and again."
 
-　　大约觉得丢脸，他的脸也红了：“读书要用钱，家里卖去了几亩地，家用本已有些吃紧，家中的耕牛忽然死了，大家都说那是苟家的人干得，我们一无凭据，二也没这个势力去和他打官司。父亲又气又急，生了场重病。庄户人家哪有余钱的，万般无奈，一张文约把剩下的四亩地卖了出来。本可以多卖几个钱，可是苟家仗着和衙门里的书办熟悉，硬拦着其他各家大户不许买，狠狠地煞了地价，拿到卖地的钱还不如平常的一半……”
+Perhaps feeling ashamed, his face turned red. "Studying costs money. My family sold a few acres of land, and our household expenses were already tight. Suddenly, our family's buffalo died. Everyone said it was done by the Gou family, but we had no evidence, and we didn't have the power to sue them. My father was both angry and anxious, and he fell seriously ill. A farmer's family has no spare money. In desperation, we sold the remaining four acres of land with a contract. We could have sold it for more money, but the Gou family, relying on their familiarity with the clerks in the yamen, prevented other large households from buying it and severely lowered the land price. The money we got from selling the land was less than half of the usual price..."
 
-　　“强买强卖。”慕敏同情地点了点头。
+"Forced sale." Mu Min nodded sympathetically.
 
-　　“地卖了，可爹知道这事之后，更是气恼，拖了几个月钱花光了人也没了——”张兴教抹着眼泪，“这还不算，苟家竟会那样坏心，跟衙门里管钱粮的师爷勾手，不曾将那四亩的钱粮过户。我家地已卖出，每年夏秋两季仍得交纳钱粮。天下哪有这样不讲道理的事？”
+"The land was sold, but when my father found out about it, he was even more angry. After a few months, the money was spent and he was gone—" Zhang Xingjiao wiped his tears. "That's not all. The Gou family was so malicious that they colluded with the master in the yamen who was in charge of money and grain, and did not transfer the ownership of the four acres of land. My family's land has been sold, but we still have to pay the money and grain taxes every summer and autumn. How can there be such an unreasonable thing in the world?"
 
-　　有这样的事情？几个人都觉得很吃惊。这在明代中后期是相当常见的事情，叫产去粮存：地卖掉，但是税务负担一点不少，买主反而不用缴税纳粮，往往造成农民失地之后被迫逃亡。
+Was there such a thing? Several people were very surprised. This was a very common thing in the middle and late Ming Dynasty, called "property gone, grain tax remains": the land was sold, but the tax burden was not reduced at all. The buyer, on the contrary, did not have to pay taxes and grain, which often caused farmers to be forced to flee after losing their land.
 
-　　“这些年合着朝廷的钱粮特别的重，又加辽饷。这可苦了我等这样的小户人家！小人找买主问为什么不将钱粮过户？文书上明明有写。苟家家主说已经对衙门里管钱粮的师爷们讲过了，钱粮没有过户与他无干。小人往城里空跑了几趟，反被师爷们骂了一顿，说小人是个刁民。”
+"In these years, the court's money and grain taxes have been particularly heavy, and the Liaodong tax has been added. This has made life difficult for small households like us! I asked the buyer why he didn't transfer the ownership of the money and grain. It was clearly written in the document. The head of the Gou family said that he had already spoken to the masters in the yamen who were in charge of money and grain, and that the failure to transfer the ownership had nothing to do with him. I made a few empty trips to the city, but was scolded by the masters, who said I was a troublemaker."
 
-　　帐篷里鸦雀无声。那些坐在地上等着过堂的俘虏们深深地被他诉说的事所打动，多数人都有这样那样的委屈，听他说得凄惨，有的人默默流泪，有的人咬紧嘴唇，想起来自己的遭遇，心中愤恨不平。
+The tent was silent. The captives sitting on the ground waiting to be interrogated were deeply moved by his story. Most of them had their own grievances. Hearing his tragic story, some shed tears silently, while others bit their lips, thinking of their own experiences, and their hearts were filled with anger and injustice.
 
-　　“卖出的地还要逼缴钱粮，完粮的限期一到，衙役们就带着火签传票，拿着水火棍、铁链、手铐，下乡抓人，如狼似虎。一到家中，不容分说，见人就打，见锅碗就砸，将小人抓到县里去追逼，每三日一逼，打得小人体无完肤，又要枷号示众……本是活不成了，幸亏当年读书的学友，有几个在县学里念书的，求了教导、训喻说情才算饶过一条小命。回到家中，那苟家又勾结着差役，以代完了小人的税粮为名，威逼着小人，虚钱实契的把小人家的几分宅基坟基都给霸了去，可怜我家历代祖坟，都被他掘了……”说到这里他把头捣在地上，哭号不止。
+"I was forced to pay the money and grain for the land I had sold. When the deadline for paying the grain tax came, the yamen runners came to the countryside with summonses with fire seals, holding water and fire sticks, iron chains, and handcuffs to arrest people, like wolves and tigers. As soon as they arrived at my house, they beat people and smashed pots and bowls without saying a word. They arrested me and took me to the county to be pressed for payment. I was pressed every three days, beaten until my body was covered with wounds, and then I was put in a cangue for public display... I was about to die, but fortunately, a few of my former classmates who were studying in the county school pleaded with the instructor and the proctor for mercy, and my life was spared. When I returned home, the Gou family colluded with the yamen runners again. On the pretext of having paid my tax and grain on my behalf, they forced me to sign a contract with a false price and a real deed, and took over my family's few plots of residential land and ancestral graves. My poor family's ancestral graves for generations were all dug up by him..." At this point, he banged his head on the ground and cried incessantly.
 
-　　这次要去打仗，村里的各家大户因为他身无长物，又没了家人产业，觉得这个人死了也没关系，就硬把他和其他三个人一起捆了送到城里当民壮，他本是在攻打博铺的那一路，因为力弱跑不快，才被抓了。
+This time, when they were going to war, the large households in the village, because he had nothing and no family property, felt that it didn't matter if he died, so they tied him up with three other people and sent them to the city as militia. He was originally on the route to attack Bopu. Because he was weak and couldn't run fast, he was captured.
 
-　　又问了几个想入伙的，事情大同小异，都是被大户官府逼迫的过不下去的人，人人都有血仇，大家听了都很同情他们。
+They asked a few more who wanted to join, and their stories were similar. They were all people who could not survive under the oppression of the large households and the government. Everyone had a blood feud, and everyone sympathized with them.
 
-　　“这事应该和执委会反映呀。”慕敏抹着红红的眼圈，“老百姓太苦了，一定要搞土改才行！”
+"This matter should be reported to the Executive Committee." Mu Min wiped her red eyes. "The common people are too miserable. We must carry out land reform!"
 
-　　郭逸的心里也很同情，不过他对土改没兴趣，对慕敏的感叹他也表示了自己的同情，免得被人说冷血，但是土改之类的话是一个字也没说——谁知道领导是怎么想的！新人更要慎言。但是从这件事情上他有了一个设想。这个想法，在结合他今天从绍宗那里听来的昨晚执委会战后检讨会的内容，他觉得有很大的可能性被采纳。
+Guo Yi also felt very sympathetic in his heart, but he was not interested in land reform. He also expressed his sympathy for Mu Min's sigh, lest he be said to be cold-blooded, but he did not say a word about land reform—who knew what the leaders were thinking! Newcomers should be more cautious in their words. But from this matter, he had an idea. This idea, combined with what he had heard from Shao Zong today about the content of the Executive Committee's post-war review meeting last night, he felt that there was a great possibility that it would be adopted.
 
-　　“打大户？”[文德嗣][y002]有些意外地看着[萧子山][y001]。
+"Attack the large households?" [Wen Desi][y002] looked at [Xiao Zishan][y001] with some surprise.
 
-　　“嗯，”[萧子山][y001]点点头，“确切地说，是打土豪劣绅。”
+"Yes," [Xiao Zishan][y001] nodded. "To be precise, it's to attack the local tyrants and evil gentry."
 
-　　“[子山][y001]，我们当时可都是讨论过的，不搞土改那套啊。”
+"[Zishan][y001], we all discussed it at that time. We are not going to do that land reform thing."
 
-　　“我们不搞土改，就是打大户，说白了，就是搞替天行道，劫富济贫那套。”[萧子山][y001]拿出几页纸，“这是郭逸的建议和他在审俘过程中获得的一些材料。利用审俘所掌握的资料，对一批有民愤的大户进行打击，一是收拢民心，警告土顽不要和我们对抗；二则可以获取大批粮食和物资。”
+"We are not doing land reform, we are just attacking the large households. To put it bluntly, we are doing the 'enforcing justice on behalf of heaven, robbing the rich to help the poor' thing." [Xiao Zishan][y001] took out a few pages of paper. "This is Guo Yi's suggestion and some materials he obtained during the interrogation of the captives. Using the information obtained from the interrogation of the captives, we will attack a group of large households with public grievances. First, to win the hearts of the people and warn the local diehards not to confront us; second, we can obtain a large amount of grain and materials."
 
-　　这几页纸上，记载了俘虏们提供的有劣迹的大户们的情况，包括人口、防御、田地、财产等等。非常的详细，有的连家里有几口猪几头牛，金银可能会藏在哪里都有，简直就是详尽的抢劫指南。穿越者只要按图索骥，不难大发横财。
+On these few pages of paper, the information provided by the captives about the large households with bad records was recorded, including population, defense, land, property, and so on. It was very detailed. Some even included how many pigs and cattle they had in their homes, and where their gold and silver might be hidden. It was simply a detailed robbery guide. As long as the transmigrators followed the map, it would not be difficult to make a fortune.
 
-　　自然，所谓的劫富济贫，自古以来主要是济自己的贫。但是这套东西对老百姓来说却有极大的吸引力，虽然老百姓实际上得不到很大的收益，但是颠覆压迫他们的日常秩序，将高高在上的人打倒在地，对许多人来说还是充满了诱惑力的。
+Naturally, the so-called "robbing the rich to help the poor" has always been mainly to help oneself. But this set of things had a great attraction for the common people. Although the common people did not actually get much benefit, subverting the daily order that oppressed them and bringing down the high and mighty people was still full of temptation for many people.
 
-　　执委会进行了讨论，这个建议获得了一批激进分子的强烈支持。对温和派来说，原来的“狩猎”是随机寻找攻击目标，很可能会杀一些不该杀的人，损害一批不该损害的人的利益，为以后的行政建设埋下隐患，采用这个方案之后“狩猎”计划可以变得目标明确，配合上能吸引鼓动百姓的口号：“除暴安良，劫富济贫”，简直有了画龙点睛的作用。双方都感到满意，得对郭逸同学也另眼相看了。
+The Executive Committee discussed it, and this suggestion received strong support from a group of radicals. For the moderates, the original "hunting" was to randomly find attack targets, which was likely to kill some people who should not be killed and harm the interests of a group of people who should not be harmed, leaving hidden dangers for future administrative construction. After adopting this plan, the "hunting" plan could become more targeted, and with the slogan that could attract and inspire the people: "eliminate the violent and pacify the good, rob the rich to help the poor," it was simply the finishing touch. Both sides were satisfied, and they had to look at Comrade Guo Yi in a new light.
 
-　　“我们确实也需要打几个大户补充下物资了。”[吴南海][y009]作为农业和伙食部门的负责人，压低了声音向大家说，“本来我就想提醒一下粮食的问题。”
+"We really need to attack a few large households to supplement our supplies." [Wu Nanhai][y009], as the person in charge of the agriculture and food departments, lowered his voice and said to everyone, "I was just about to remind everyone about the food problem."
 
-　　他打开一个笔记本：“我们在粮食储备是按每人每天1公斤，连续供应60天的量储备大米和面粉，总储备量是35吨。D日之后，大多数人实际上是按每天600－800克配给，因为我们能配给比较多的蛋白质和脂肪，包括罐头、速食品和海鱼，减少了了碳水化合物的需求。这样每天消耗的粮食为350公斤，所以粮食消耗比预计的少，储备比预计可多维持大约15天。但是这个数字是不包括俘虏的。
+He opened a notebook: "Our grain reserves are based on 1 kg per person per day, with a continuous supply of rice and flour for 60 days. The total reserve is 35 tons. After D-day, most people are actually allocated 600-800 grams per day, because we can provide more protein and fat, including canned food, instant food, and sea fish, which reduces the demand for carbohydrates. In this way, the daily consumption of grain is 350 kg, so the grain consumption is less than expected, and the reserve can last for about 15 more days than expected. But this number does not include the captives.
 
-　　“邬德报今天给我的俘虏的人数是138，按每人每天配给300克计算——如果要让他们干重体力活，这个配给实际上是不够的——从明天开始每天就得消耗多40公斤粮食，这不是小数字，要尽快开辟粮食的来源。”
+"The number of captives that Wu De reported to me today is 138. Based on a daily ration of 300 grams per person—if we want them to do heavy physical labor, this ration is actually not enough—from tomorrow on, we will consume an extra 40 kg of grain every day. This is not a small number. We need to open up a source of grain as soon as possible."
 
-　　“我们的自己的粮食种植计划呢？”[萧子山][y001]知道[吴南海][y009]的农业组带了无数现代农业的精华。
+"What about our own grain planting plan?" [Xiao Zishan][y001] knew that [Wu Nanhai][y009]'s agriculture group had brought countless essences of modern agriculture.
 
-　　“过去没有人手，现在俘虏多了就好办了。海南在21世纪可以一年三收。不过现在是小冰河期间，海南到底冷到什么程度我还不清楚，得问了俘虏才能决定种什么。”
+"In the past, we didn't have the manpower. Now that there are more captives, it will be easier. Hainan can have three harvests a year in the 21st century. But now it's the Little Ice Age. I'm not sure how cold Hainan is. I have to ask the captives before I can decide what to plant."
 
-　　“我记得明代的海南还下过雪。”
+"I remember that it even snowed in Hainan during the Ming Dynasty."
 
-　　“这应该是特例，不过气温偏低几度是肯定的，一年二收总可以。希望多拨给我一些俘虏，实话说我对宅男们种地不大放心……”
+"This should be a special case, but it's certain that the temperature is a few degrees lower. Two harvests a year should be possible. I hope to be allocated more captives. To be honest, I'm not very confident in the otaku's ability to farm..."
 
-　　[萧子山][y001]在自己的本子上记了下他的要求。
+[Xiao Zishan][y001] jotted down his request in his notebook.
 
-　　“还有食盐，得尽快找到来路或者自产。农业组有一吨食盐，眼下暂时够用，不过现在因为要制作许多腌制品，消耗相当快。其他部门也有需要，都向农业组来申请，这让我挺难办的。”
+"And salt, we need to find a source or produce it ourselves as soon as possible. The agriculture group has one ton of salt, which is enough for now, but now because we need to make many preserved products, the consumption is quite fast. Other departments also have needs and all apply to the agriculture group, which makes it difficult for me."
 
-　　“盐不难办吧？海南我记得是中国最早开展大规模晒盐的地方之一，北部湾、琼州海峡沿岸的盐场很多。”
+"Salt shouldn't be difficult, right? I remember that Hainan was one of the first places in China to carry out large-scale salt drying. There are many salt fields along the coast of the Beibu Gulf and the Qiongzhou Strait."
 
-　　“得尽快开工建设一个盐场。”
+"We need to start building a salt field as soon as possible."
 
-　　“这个好说，”[王洛宾][y003]信心满满的，“我小时候在广西，经常去海边的盐场玩，知道怎么晒。”他皱了下眉，“不过晒盐可是个苦活力气活，都是机械化生产还好说，用人力的话现在劳动力不太够。”
+"That's easy to say," [Wang Luobin][y003] said with full confidence. "I often went to the salt fields by the sea when I was a child in Guangxi. I know how to dry salt." He frowned. "But drying salt is hard and strenuous work. It's fine if it's all mechanized, but if we use manpower, we don't have enough labor now."
 
-　　“不用费事，我们可以去抢……”于鄂水翻开了一本书，“根据县志记载，离我们不远的马袅半岛上就有一个官盐场，想来那里的盐足够我们用的。”
+"No need to bother, we can go and rob..." Yu E'shui opened a book. "According to the county annals, there is an official salt field on the Maniao Peninsula not far from us. I think the salt there is enough for us to use."
 
-　　“去抢盐吧，化工部门很需要这个，得分些人手。”
+"Let's go rob the salt. The chemical department needs it very much. We need to spare some manpower."
 
-　　“我们梳理一下到底有哪些项目要满足。再谈如何分配人力。”
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+"Let's sort out what projects need to be met. Then we can talk about how to allocate manpower."
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
 [y003]: /characters/y003 "王洛宾"
 [y009]: /characters/y009 "吴南海"
