--- a/_posts/2009-11-24-2-03800.md
+++ b/_posts/2009-11-24-2-03800.md
@@ -1,71 +1,71 @@
 ---
 layout: post
-title: 第三十八节 建筑材料
+title: "Chapter 38: Building Materials"
 category: 2
 path: 2009-11-24-2-03800.md
 tag: [normal]
 ---
 
-　　正当执委会的各个专业组为劳动力优选权争论的时候，[萧子山][y001]又接到了冉耀的电话：在审俘过程中发现了黎人俘虏。
+Just as the various specialized groups of the Executive Committee were arguing over priority for labor allocation, [Xiao Zishan][y001] received another call from Ran Yao: they had discovered Li tribesmen among the captives during interrogation.
 
-　　“真的？”[萧子山][y001]吃了一惊，在海南岛这个地方，黎族向来是一支很强大的力量，翻开各个县的县志，“黎情”都要单独占据一个篇幅，从元代以来，几乎没有哪一年黎民不发动暴动的，汉黎冲突相当激烈，防黎一直是当地官府的重要任务。因为黎人的抵抗，汉人的移民一直没能深入到海南岛的核心区域，穿越者要在海南发展壮大在黎族问题上必须极其谨慎才行。
+"Really?" [Xiao Zishan][y001] was startled. On Hainan Island, the Li people had always been a formidable force. A look through the county gazettes showed that the "Li Situation" always warranted its own section. Since the Yuan Dynasty, there was hardly a year without a Li uprising. The conflict between the Han and the Li was intense, and defending against the Li was a major task for the local government. Due to their resistance, Han Chinese immigrants had never managed to penetrate the island's core. For the transmigrators to grow and thrive in Hainan, they had to be extremely cautious in their dealings with the Li.
 
-　　“怎么个情况？”
+"What's the situation?"
 
-　　“据他们说是县里征发来当弓弩手的，一共来了三十个，现在我们抓到了八个。”冉耀在电话里说，“另外告诉你件事情，记得那一家子人吗？就是偶然卷入的——”
+"They say they were conscripted by the county as crossbowmen. Thirty of them came, and we've captured eight," Ran Yao said over the phone. "Also, let me tell you something else. Remember that family that got accidentally involved?"
 
-　　“记得，那女的不是警察出身么，派给你去审俘了。”
+"I remember. The woman was a former police officer, right? I sent her to you for interrogations."
 
-　　“她就是黎族，而且祖籍是海南，很妙吧？我觉得可以利用这个关系。”
+"She's Li, and her ancestral home is Hainan. Pretty neat, huh? I think we can use this connection."
 
-　　“我记得她一口川普？现在的少数民族很多都是水分大大的。再说她早就不在当地生活了，还能知道什么。”
+"I remember her having a Sichuan accent. A lot of ethnic minorities these days are 'ethnic' in name only. Besides, she hasn't lived there for a long time, what could she possibly know?"
 
-　　“不，她对本族的事情知道的很多。几个黎人俘虏现在对她五体投地呢，”小灵通里传来了冉耀的笑声，“你看，人才有时候就出现在不经意之间。”
+"No, she knows a lot about her people. A few of the Li captives are completely in awe of her," Ran Yao's laughter came through the PHS phone. "See? Talent sometimes pops up when you least expect it."
 
-　　郭逸这边已经差不多都甄别出来了：绝大多数人都是农民——小地主往往是亲身参加劳动的，有几个算匠人，实际也是半农半工，农闲的时候烧些瓦器，或者替人修房盖屋子的泥水匠。稍微有些技术的是一个粗木匠，是个半老头子。识字的只有一个，就是张兴教了，他被单独叫出来，跟着熊卜佑学习普通话，当上了整个劳动队的文书，负责记工之类的事情。
+Meanwhile, Guo Yi had nearly finished screening the captives. The vast majority were farmers—even small landowners often worked the fields themselves. A few were artisans, but they were really just part-time farmers, firing some pottery or working as masons during the off-season. The only one with any real skill was a rough carpenter, a man past his middle age. Only one person was literate: Zhang Xingjiao. He was singled out to learn Mandarin from Xiong Buyou and was made the clerk for the entire labor force, responsible for recording work points and other administrative tasks.
 
-　　邬德把匠人单独抽出来组成一个队，其他人除了二十多个伤员，全部分成五个劳工队，由最早的五个俘虏当队长。在编组的时候，他根据审俘的记录，把临高土著、福建射耕人、各地移民全都打乱了混编，还是搞那套互相制约的那套——反正你们不能团结起来。林兴他们如今都成了队长，忘记了自己半俘虏半奴隶的身份，一个个还觉得蛮高兴的，不等邬德吩咐，就给自己都做了笞棍，准备卖力的督促新来的可怜虫了。
+Wu De separated the artisans into their own team. The rest, aside from about twenty wounded, were divided into five labor teams, led by the first five captives. During the organization, based on the interrogation records, he deliberately mixed the Lingao natives, the Fujianese "slash-and-burn" farmers, and immigrants from other regions. He was still using his old divide-and-conquer strategy—anything to prevent them from uniting. Lin Xing and the other new team leaders, having forgotten their own half-captive, half-slave status, were quite pleased with their promotion. Without waiting for orders, they had already made themselves whips, eager to supervise the new wretches.
 
-　　严格的等级关系，上下级之间的绝对权力和通过权力得到的利益，这些东西在人类群体里是极其有诱惑力的。在部队和司法机关工作过许多年的邬德深谙这一点，所以他刻意的去深化这些东西，五个队长每人都发了一顶难看的藤编安全帽——这是工业委员会不成功的试制品，本来打算当柴火烧掉的，邬德却把这些帽子都要了回来，把俘虏们的地位用有帽子和无帽子这样的明显标志物区分出来。
+Strict hierarchy, absolute power between superiors and subordinates, and the benefits derived from that power—these are incredibly seductive forces in any human group. Having worked in the military and judiciary for many years, Wu De understood this well. He deliberately reinforced this structure. Each of the five team leaders was issued an ugly, rattan safety helmet—a failed prototype from the Industrial Committee, originally destined for the firewood pile. Wu De had salvaged them, using the clear visual distinction of "hatted" and "unhatted" to delineate the captives' status.
 
-　　因为工程的急需，劳工队全部被派给了建筑组生产建筑原料：砖。
+Due to the urgent construction needs, all labor teams were assigned to the construction group to produce the most basic building material: bricks.
 
-　　现代建筑已经从砖瓦渐渐地转向使用钢筋水泥，但是烧制的粘土砖依然不失为一种最广泛经济的材料，工程建筑组自然也不会放弃。
+While modern construction was moving towards reinforced concrete, fired clay bricks remained one of the most common and economical materials, and the construction group had no intention of abandoning them.
 
-　　根据侦察队的消息，他们在距离百仞滩三公里外找到了一个砖瓦场，这是一个典型的传统砖瓦场。有三座土圆窑，工人们虽然都跑了，但是里面的东西都还在：烧制好的砖瓦、阴干的砖坯和许多“熟土”。
+The reconnaissance team had located a brick and tile works three kilometers from Bairen Beach. It was a typical traditional operation with three earthen round kilns. Though the workers had fled, everything else was left behind: fired bricks and tiles, air-dried green bricks, and a large quantity of "prepared clay."
 
-　　烧制砖瓦的工序是相当烦琐的，首先要把生土开采出来——也就是不含有机质的粘土，将生土晒干、碾碎，加水之后再反复碾踏，做成熟土，再制成砖坯。砖坯不能直接入窑去烧，水分太多的话会直接在窑里烧裂变形，所以还得阴干十天半月，阴干期间不能见太阳，不能有强风，更不能遇到寒冷，所以常规情况下冬季是不能烧砖瓦的，阴干之后的砖坯才能入窑烧制。
+The process of firing bricks was tedious. First, raw clay (clay without organic matter) had to be extracted. It was then sun-dried, crushed, mixed with water, and repeatedly trampled to create "prepared clay," which was then molded into green bricks. These green bricks couldn't be fired immediately; too much moisture would cause them to crack and warp in the kiln. They needed to be air-dried for ten to fifteen days, sheltered from sun, strong wind, and cold. This meant that, traditionally, bricks couldn't be fired in winter. Only after proper drying could they be placed in the kiln.
 
-　　如果让穿越者们自己去制砖烧砖，很难想象生产效率的问题，不过穿越者们有一台联合制砖机，用一台锅驼机进行驱动，制砖坯效率就仅仅在于他们能开采出多少生土了。
+If the transmigrators had to make and fire bricks by traditional methods, the efficiency would be abysmal. Fortunately, they had a combined brick-making machine powered by a portable steam engine. With this, their brick production rate was limited only by how much raw clay they could excavate.
 
-　　梅晚嫌土圆窑的生产效率太低，而且装窑需要熟练的老师傅才干得了，不是他们这些看说明书的生手能做得。好在这里有大量现成的砖可用，就开工建造了一座16孔的轮窑。
+Mei Wan considered the earthen kilns too inefficient. Moreover, loading a kiln was a skilled job, not something novices like them, working from a manual, could manage. Luckily, there was a large supply of ready-made bricks on site. They decided to use them to build a 16-chamber Hoffman kiln.
 
-　　轮窑是一种“洋窑”，当然比起更先进的遂道窑之类的现代化砖窑它已经是很落后了，但在这个时空绝对是一种先进的事物。
+The Hoffman kiln was a "foreign" design. While primitive compared to modern tunnel kilns, in this time and place, it was a technological marvel.
 
-　　它是一种连续生产窑，可以同时装坯、出砖、清扫。窑由很多互相连通的小室组成，如同一条环形的遂道，四周有许多窑门，所有的烟道都和窑中心的总烟道连接，燃料则是从窑顶的加料孔加入的。轮窑工作的时候分为：干燥、预热、煅烧和冷却四个工作带。一个16室的窑，第一室在出砖、第十六室已经在清扫，第十五室同时在装坯，接着第二室就可以出砖，第一室进行清扫，第十六室内可以装坯了。一旦点火就可以不间断的二十四小时连续生产，在工作效率和热能利用上都是传统窑望尘莫及的，一个普通的轮窑，一年可出砖瓦五千多万块。
+It was a continuous production kiln, allowing for loading, firing, cooling, and unloading to happen simultaneously. The kiln consisted of a series of interconnected chambers forming a circular tunnel, with numerous doors along the perimeter. All flues connected to a central chimney, and fuel was added through ports in the roof. The process was divided into four zones: drying, preheating, firing, and cooling. In a 16-chamber kiln, as one chamber was being unloaded, another was being cleaned, and another was being loaded. Once lit, it could operate 24/7, offering efficiency and heat utilization far beyond traditional kilns. A standard Hoffman kiln could produce over fifty million bricks and tiles a year.
 
-　　为了不浪费时间，在安装机械和建造轮窑的同时，梅晚决定先把已经阴干的那些砖瓦坯都烧出来，不过土窑的砖坯装窑是个技术活，无论是穿越者还是劳工谁也没干过。消息传回执委会，情报资料组的[罗铎][y011]再次发挥了他两脚字典的功能，很快从电脑硬盘里找到了一本1958年出的《土法制砖瓦》的小册子的电子版，不到一小时，这本打印出来的小书就被火速送到了窑上，劳工们惊讶地看到这位“海贼匠人”用一本书在指导他们怎么装窑——这可是只有老师傅才知道的秘密！
+To save time, while the machinery was being installed and the Hoffman kiln was being built, Mei Wan decided to fire the existing air-dried green bricks. However, loading the earthen kiln was a specialized skill that neither the transmigrators nor the laborers possessed. When word reached the Executive Committee, [Luo Duo][y011] of the Intelligence and Information Group once again proved his worth as a walking encyclopedia. He quickly located a digital copy of a 1958 booklet titled "Earthen Methods for Making Bricks and Tiles" on a hard drive. Within an hour, a printed copy was rushed to the kiln site. The laborers were astonished to see this "pirate artisan" directing them on how to load the kiln using a book—a secret previously known only to master craftsmen!
 
-　　砖窑附近有大批的茅草地，梅晚询问了过去在砖窑打过散工的劳工才知道这是作为燃料特意种的，土窑用这样的“软柴”才能烧得好，硬柴火力太猛，不容易控制火头。这些燃料，自然也被穿越众毫不客气的利用上了。
+Near the kiln was a large field of thatch. After questioning some laborers who had done odd jobs there, Mei Wan learned it was intentionally grown as fuel. Earthen kilns required "soft firewood" like this to burn properly; hardwood burned too intensely, making the fire difficult to control. Naturally, the transmigrators put this fuel to good use.
 
-　　土窑在烧砖的时候，梅晚指挥着劳工队，不断的割草、挖土，草捆和土堆都堆得老高老高。有些俘虏觉得海贼们多半是要把他们劳作至死了——这么多的土，不吃不睡也用不完。
+While the earthen kiln was firing, Mei Wan directed the labor teams to cut grass and dig clay, creating massive piles of both. Some captives began to despair, thinking the pirates meant to work them to death—there was so much clay, they couldn't possibly use it all, even if they worked without rest.
 
-　　当锅驼机调整完毕，突突的冒起了黑烟，飞轮转动着，带动联合制砖机运转起来的时候，俘虏们只看见成堆的熟土被倒进那个钢铁的大开口里，许多铁件眼花缭乱的上下起伏轰鸣着，接着就看到平整的土坯象被施了法术一样，被整齐的切成了整板整板的砖坯！就算是最熟练的制砖师傅，也不能做得这么快！所有人都傻眼了——海贼们什么都会！而且他们造起东西来的速度，根本不是凡人的力量可以做到的，有些人干脆害怕地跪在轰鸣的机器前连连磕头了。
+Then, the portable steam engine sputtered to life, belching black smoke. The flywheel began to turn, powering the combined brick-making machine. The captives watched, mesmerized, as piles of prepared clay were fed into the machine's great steel maw. A dazzling array of iron parts whirred and roared, and then, as if by magic, smooth, uniform green bricks emerged, neatly cut into boards! Not even the most skilled brick-maker could work this fast. Everyone was dumbfounded. The pirates could do anything! The speed at which they created things was beyond mortal comprehension. Some of the captives, terrified, fell to their knees and kowtowed before the roaring machine.
 
-　　“磕什么头，快去运料！”梅晚对着发呆的林兴吼叫着。
+"What are you bowing for? Get back to moving materials!" Mei Wan yelled at a stunned Lin Xing.
 
-　　“知道了！首长。”这个称呼不知道是哪个吃饱了没事干的人教给他的，他现在见穿越众就叫首长。
+"Yes, Chief!" Lin Xing replied. He had picked up the title from some bored transmigrator and now used it for all of them.
 
-　　“干活！干活！”他卖力的挥舞着棍子，“去运土，快点，动作慢的都给丢那铁口里去！”
+"Work! Work!" he shouted, brandishing his stick. "Move the clay! Hurry up! Anyone who's too slow gets thrown into that iron mouth!"
 
-　　这种恐吓比他的棍子有效的多，每个俘虏都对这机器产生了迷信般的恐怖，个个都十分卖力的去干活了，生怕干得慢了真给丢机器口里去——这种东西怕是要用活人作祭品吧？
+The threat was far more effective than his stick. A superstitious terror of the machine gripped every captive. They worked with frantic energy, terrified of being fed to the machine as a living sacrifice.
 
-　　制出来的砖坯，被手推车拉到堆料场上，原本的阴干棚都腾空了，正好用来堆这些新制的砖坯，所有的砖都是按照过去的八五砖标准制造的。
+The newly made green bricks were carted to a stacking area. The original drying sheds had been cleared out and were now used to store the machine-made bricks, all produced to the old "85 brick" standard.
 
-　　显然，机器的生产速度大大超越了这个时代，还没到晚上，临高烧砖匠人准备用好几个月的熟土都被消耗殆尽了，机器只好暂时停了下来。
+The machine's productivity was far beyond anything this era had ever seen. Before evening, the entire supply of prepared clay, which would have lasted the Lingao brick-makers for months, was exhausted. The machine fell silent.
 
-　　要建造轮窑，梅晚的另外一个任务就是要造出水泥来。对他来说，水泥就是打个电话叫人送货的事情。即使D日之后用到的水泥也都是从原来的时空带来的。现在要从头开始制造他就完全没概念了。梅晚知道这世界上有土水泥这么回事，但是怎么造，造出来能有什么样的性能就不清楚了。
+To build the Hoffman kiln, Mei Wan had another crucial task: producing cement. Back in his own time, getting cement was as simple as making a phone call. Even the cement they'd used since D-Day had been brought with them. Now, faced with making it from scratch, he was completely lost. He knew of something called "earthen cement," but he had no idea how to make it or what its properties would be.
 
-　　在现代社会，水泥工业已经成为一种高度专业化，机械化的大生产，它涉及到许多特殊的大型专用设备，如破碎机、回转窑、球磨机等等。复制这样的大型设备对穿越者来说太奢侈了，即使买来现成的设备安装，这类巨型设备也不是他们的能力可以搞定的。
-[y001]: /characters/y001 "萧子山"
-[y011]: /characters/y011 "罗铎"
+In modern society, cement production is a highly specialized, mechanized industry involving massive, dedicated equipment like crushers, rotary kilns, and ball mills. Replicating such machinery was a luxury the transmigrators couldn't afford. Even if they had the equipment, they lacked the capacity to install and operate such behemoths.
+[y001]: /characters/y001 "Xiao Zishan"
+[y011]: /characters/y011 "Luo Duo"
