--- a/_posts/2009-11-25-2-03900.md
+++ b/_posts/2009-11-25-2-03900.md
@@ -1,64 +1,65 @@
 ---
 layout: post
-title: 第三十九节 水泥
+title: "Chapter 39: Cement"
 category: 2
 path: 2009-11-25-2-03900.md
 tag: [normal]
 ---
 
-　　[王洛宾][y003]采购过一整套立窑法生产水泥的小水泥设备，不过这套设备运转起来需要使用大量的煤，而穿越者们暂时还没有煤。
+[Wang Luobin][y003] had procured a complete set of small-scale cement production equipment that used a vertical kiln, but it required a large amount of coal, which the transmigrators currently lacked.
 
-　　其他水泥所需要的原料，如粘土、石灰、石膏在当地都有所发现，这个砖窑的取土场的粘土本身含沙量少，土质偏红——含铁质高，很适合烧水泥。石灰的话，虽然博铺那边用贝壳蛎房烧出来的石灰碳酸钙含量偏低，但是取土坑附近也能找到白垩土的矿层，石膏暂时在附近还没有发现，不过加不加石膏问题不大。
+The other necessary raw materials—clay, lime, and gypsum—had all been found locally. The clay from the brickworks' quarry was low in sand and reddish in color, indicating a high iron content, which made it ideal for cement production. While the lime produced from shells at Bopu was low in calcium carbonate, a chalk deposit was found near the quarry. Gypsum hadn't been discovered nearby yet, but its absence wasn't a critical problem.
 
-　　[王洛宾][y003]考虑过再三之后，决定暂时不安装对温度和原材料都有一定要求的成套设备，而是因陋就简的烧制一种代水泥来满足目前的施工需求。这种代水泥又叫做“人工火山灰水泥”，有的地方过去农村也烧过。它不需要复杂的设备流程，简单地说，就是把烧成的砖瓦或者陶器破碎碾细，也可以直接将石灰和粘土放在窑内煅烧。这种代水泥的工序极简单，煅烧温度600－800摄氏度就可以，比烧制硅酸盐水泥所需要的1450摄氏度低得多，性能大致和最古老的“火山灰水泥”类似。云南的滇越铁路就是用这种水泥修筑的，抗战期间广泛用于西南大后方的基础建设。
+After much consideration, [Wang Luobin][y003] decided against installing the full equipment set, which had strict temperature and raw material requirements. Instead, he opted for a simpler, makeshift method to produce a cement substitute to meet immediate construction needs. This substitute was known as "artificial pozzolanic cement," a type that had been produced in some rural areas in the past. It didn't require a complex process; simply put, fired bricks, tiles, or pottery were crushed into a fine powder. Alternatively, lime and clay could be calcined directly in a kiln. The process was extremely simple, requiring a calcination temperature of only 600-800°C, far lower than the 1450°C needed for modern Portland cement. Its properties were similar to ancient "pozzolanic cement." The Yunnan-Vietnam Railway had been built with this type of cement, and it was widely used for infrastructure in China's southwestern rear during the Anti-Japanese War.
 
-　　[王洛宾][y003]只是知道有这个东西，是不是能用还不了解。所以先叫人把砖场里烧好的红砖取一批过来做实验。劳工们用手工一一敲碎把砖头敲成小块，磨细的工作原来打算用人力或者马力牵引石碾的——他们在百仞滩的采石场找到了不少大大小小的石碾——运行了一小时后发觉效率实在低得可怕：才碾了10公斤。
+[Wang Luobin][y003] knew of its existence but wasn't sure of its viability. He ordered a batch of fired red bricks from the brickyard for an experiment. Laborers manually broke the bricks into small pieces. The initial plan for grinding was to use human or animal-powered stone rollers—they had found plenty at the Bairen Beach quarry—but after an hour, the efficiency was abysmal, yielding only 10 kilograms of powder.
 
-　　碾细过筛之后，[王洛宾][y003]把这些粉末和石灰混合，然后加水拌匀，在建筑组的众目睽睽之下，这些混合物被用来砌一堵墙。大家都很兴奋，想亲眼看看这个传说中的代水泥是不是真得有效。
+After grinding and sifting the powder, [Wang Luobin][y003] mixed it with lime and water. Before the watchful eyes of the entire construction team, the mixture was used to lay a wall. Everyone was excited to see if this legendary substitute cement would actually work.
 
-　　干结之后证明这种烧粘土的代水泥完全可用，当然不能和真正的硅酸盐水泥相比，但是可以用来作为建筑材料的黏合剂，甚至能制造强度要求不大的混凝土。
+Once it dried, the fired-clay cement proved perfectly usable. While it couldn't compare to true Portland cement, it served as an effective binder for building materials and could even be used to make low-strength concrete.
 
-　　这个发现令所有人振奋。连砸砖头的泥水匠赵五都是一脸兴奋的神情——他做泥水匠十几年了，砌墙造屋，都是黄土、石灰和水拌匀了作黏合。最考究的，也不过是加了糯米汁的灰泥，这群人竟然用砖头碾粉就做出来可以把砖头牢牢黏合在一起的灰泥！这太超乎他的想像了，他们真得是海贼么？这一招可得记着。因为学到了这手，甚至有点高兴自己被俘了。
+This discovery electrified everyone. Even Zhao Wu, the mason tasked with smashing bricks, was visibly thrilled. In his fifteen years as a mason, he had always used a mixture of yellow mud, lime, and water as mortar. The most sophisticated binder he knew was a plaster mixed with glutinous rice juice. Now, this group of "pirates" had created a mortar that could bind bricks firmly together simply by grinding up other bricks! It was beyond his imagination. Were they really just pirates? He made a mental note to remember this technique. He was almost glad he had been captured.
 
-　　水泥是穿越者们真正意义上的第一件现代工业产品，虽然它还不是太合格，但是对穿越者的建设来说这是关键的一步，水泥可是现代建筑的基本原料。
+This cement was the transmigrators' first truly modern industrial product. Though imperfect, it was a critical step forward. Cement was the fundamental material of modern construction.
 
-　　不过碾磨的效率还是太低了，按这个水平，24小时不断的碾磨产量也只有240公斤，低得不值一提。
+However, the grinding efficiency was still far too low. At the current rate, they could only produce 240 kilograms in 24 hours of continuous work—a negligible amount.
 
-　　机械组的人研究之后，制造出了一台简易的自动碾磨机。他们用了二个从百仞滩采石场找来的石碾，做了一个电动的双碾，用穿心轴连接于立轴上，立轴上装有轴承，以减轻转动时候的阻力，用一个安有甩轮的摇动架通过铁链带动伞形齿轮，使石碾运转。
+The mechanics team designed and built a simple automated grinding mill. Using two stone rollers from the quarry, they constructed an electric double-roller mill. The rollers were connected by a central axle to a vertical shaft fitted with bearings to reduce friction. A flywheel on a rocking frame drove a set of bevel gears via a chain, turning the stone rollers.
 
-　　但是加料和筛料还是手工操作，不仅效率差，而且容易搞成尘肺——这是个很麻烦的职业病，几乎没救得。虽然干这些活的都是俘虏的土著，但是劳动力对穿越者来说也是一种财富。[展无涯][y004]就带着几个机械组员研究了一番，在伞形齿轮上加了一个木轮，用皮带带动一个筛粮食用的风车罗，物料由立轴顶端的漏斗加入，碾出的粉料由坡道自动流下，落入风车罗，利用风力将粗细粒分开，粗粒由坡道旁的输送料斗重新送回到石碾上面的漏斗，再次入碾子碾细。这套铁木石合作的土装置每天能粉碎差不多1吨的碎砖料。
+Feeding and sifting were still manual, which was inefficient and created a serious risk of silicosis—a deadly occupational disease. Although the laborers were captives, their lives were still valuable assets. [Zhan Wuya][y004] and a few mechanics devised an improvement. They added a wooden wheel to the bevel gear, which drove a grain-winnowing fan with a belt. Material was fed through a funnel at the top of the vertical shaft. The ground powder flowed down a ramp into the winnower, where airflow separated the coarse particles from the fine. The coarse particles were carried by a conveyor back to the funnel to be ground again. This ingenious contraption of iron, wood, and stone could process nearly a ton of crushed brick per day.
 
-　　有了水泥，砌造轮窑还需要耐火砖。耐火砖是现代工业的基石之一，没有这个东西，不用说轮窑、水泥窑，连未来的高炉都没指望。幸好临高本地就出产耐火材料，穿越者们从砖窑附近找到了烧制耐火砖的氧化铝和氧化硅，很容易的烧出了耐火砖。
+With cement secured, the next requirement for the Hoffman kiln was refractory bricks. Refractory bricks are a cornerstone of modern industry; without them, not only kilns but also future blast furnaces would be impossible. Fortunately, Lingao had local sources of refractory materials. The transmigrators found alumina and silica near the brickworks and were able to fire the necessary bricks easily.
 
-　　有了耐火砖和水泥，修建一座轮窑在建筑组的手里就是手到擒来了，几天以后，轮窑的砖红色烟囱第一次向空中喷吐出浓厚的黑烟。
+With refractory bricks and cement, building the Hoffman kiln was a straightforward task for the construction team. A few days later, its tall, brick-red chimney belched thick black smoke into the sky for the first time.
 
-　　“靠，真是太美了。”有人在喃喃自语。穿越者们的眼神中露出了沉醉的神情，过去被大家所厌恶的，象征着落后、污染的景象，现在却被穿越者们视为最美的事物，[王洛宾][y003]看着那烟雾，多少有点明白为什么当年伟大领袖对北京的古城墙一点都不看重，说拆就拆，却发出了“北京的烟囱要象树林一样密集”的豪言壮语了——古城墙对当时的中国人来说是熟悉到不能再熟悉的东西，而当时稀缺的现代工业才是一个国家社会进步的标志。
+"Damn, that's beautiful," someone murmured. A look of rapt fascination filled the transmigrators' eyes. The smoke, a symbol of pollution and backwardness they had once despised, was now the most beautiful sight in the world. Watching it, [Wang Luobin][y003] began to understand why the Great Leader had shown no sentiment for Beijing's ancient city walls, ordering their demolition while proclaiming that "Beijing's chimneys should be as dense as a forest." The ancient walls were mundane to the people of that time; it was the scarcity of modern industry that symbolized a nation's progress.
 
-　　此时这座轮窑的砖红色烟囱昂然的树立在文澜江畔的青山绿水间，对穿越者来说没有任何的违和感，宣告着穿越者的工业化时代正式开始。
+Now, the proud chimney of their kiln stood against the green hills and clear waters of the Wenlan River. To the transmigrators, it wasn't an eyesore; it was a declaration. Their industrial age had officially begun.
 
-　　轮窑在开始烧之前要进行暖窑，建筑组又出发到博铺去，在那里为木材加工厂建设一座木材干燥窑，有了这座合乎标准的干燥窑，木材组就能源源不断的提供合格的木材制品给百仞城的工地，而不是现在用土窑干燥出来的湿度不一随时会干缩变形的临时代用木料。这件事情，[王洛宾][y003]就不参加了，干燥窑的尺寸材料，反正[罗铎][y011]会去找书的，他在广西生活的时候也没见过这玩意。
+The kiln needed to be pre-heated before firing could begin. The construction team set off for Bopu to build a wood-drying kiln for the timber processing plant. With a proper drying kiln, the timber team could provide a steady supply of quality lumber for the Bairen City construction site, replacing the inconsistently dried, warp-prone wood from the current earthen kilns. [Wang Luobin][y003] didn't join them. He figured [Luo Duo][y011] could find the necessary plans and specifications in a book; he'd never seen such a thing during his time in Guangxi.
 
-　　看着建筑工程队爬上农用车向博铺开去，他忽然想起了一件事情，马上拨了一个电话给梅晚：“你和木材组的人商量下，再修一个木材干馏窑。”
+As he watched the construction team drive off in their farm truck, a thought struck him. He quickly called Mei Wan. "Talk to the timber team and have them build a wood carbonization kiln as well."
 
-　　“干馏窑？”梅晚不知道这是什么东西。
+"A carbonization kiln?" Mei Wan asked, unfamiliar with the term.
 
-　　“就是烧炭的窑，一会你和[罗铎][y011]说，他知道的。你们先研究一下，看看什么时候能够投产。”
+"It's for making charcoal. Talk to [Luo Duo][y011]; he'll know. You guys look into it and see when you can get it into production."
 
-　　既然没有煤炭，只有先用木炭来代用了。干馏木材，不仅可以得到木炭，还能获得用作化工原料的木焦油，这是种复杂的化合物，能提炼出许多有用的物质来。木炭本身的发热量也不逊于煤。
+With no coal, charcoal was the next best thing. The dry distillation of wood would not only produce charcoal but also wood tar, a complex chemical compound from which many useful substances could be extracted. Furthermore, charcoal's energy output was comparable to coal.
 
-　　伙食办用炊事车给砖瓦厂劳动的工人们送来的饭。现在，邬德通过棍棒已经教了他们排队，排队是一种基本的社会秩序，是每个人大体都能公平的获取资源的一种表现，中国人之所以不喜欢排队，似乎无关于个人素质，或许很大程度上和长期的社会资源匮乏有关，谁遵守秩序谁就会吃亏，所以久而久之大家都不喜欢排队了，有机会就会猛冲，把其他人挤到后面去。邬德觉得这话多少有些道理。
+The mess hall sent a food cart to the workers at the brickworks. By now, Wu De had used his stick to teach them the concept of lining up. Queuing was a fundamental aspect of social order, a way to ensure reasonably fair access to resources. Wu De mused that the Chinese dislike for queuing wasn't a matter of personal character, but likely a product of long-term resource scarcity. In such an environment, following the rules meant losing out, so everyone learned to rush and push. He felt there was some truth to that.
 
-　　就如同现在的分饭一样，尽管每队都有队长在维持秩序，但是整个队伍还是有点乱糟糟的，每个人都希望自己能排到前面去，只是迫于穿越者的威摄力，队伍的秩序才勉强的保存着。
+Just like at mealtime now. Despite the team leaders trying to maintain order, the lines were still a chaotic mess. Everyone wanted to be first, and only the fear of the transmigrators kept the lines from collapsing completely.
 
-　　邬德对自己的劳工们的工作还是满意的，在整个工程期间，他看似只是随便走走，转转，观察着这支队伍。多数人干活还是比较卖力的，当然不是他们的自觉性高，而是五个队长之间的竞争意识，谁都不希望自己的队在邬德的面前表现的太差——对老百姓来说总是“汉奸比鬼子更坏”，这五个队长，在督促干活方面的确十分的卖力，但这还不够。邬德知道俘虏们的卖力还仅仅是因为害怕，要自觉自愿的努力干活需要其他方面的刺激。
+Wu De was generally satisfied with his laborers' performance. Throughout the project, he had wandered the site, observing the teams. Most men worked hard, not out of any sense of duty, but because of the rivalry between the five team leaders. No one wanted their team to look bad in front of Wu De. True to the old saying, "the collaborators are often crueler than the invaders," the five leaders were extremely zealous in pushing their men. But that wasn't enough. Wu De knew their diligence was born of fear. To make them work hard willingly, he needed a different kind of motivation.
 
-　　邬德决定就从伙食上着手。俘虏们每人都领到了一碗稀饭之后，邬德叫人抬来一个筐子。这个由机械组编出来的奇形怪状的东西散发着一股干海味的腥臭味。是伙食办不成功的咸鱼作品……
+He decided to start with food. After each captive had received his bowl of thin porridge, Wu De had a basket brought forward. The strange-looking basket, woven by the mechanics team, reeked of dried seafood. It contained the mess hall's less-than-successful attempt at salted fish.
 
-　　“今天是王田的队伍干得最好最多，”邬德在土堆上宣布道，“所以他们一队每人可以多吃一条咸鱼。”
+"Today, Wang Tian's team worked the hardest and produced the most," Wu De announced from atop a mound of earth. "Therefore, every man in his team gets an extra salted fish."
 
-　　这个额外的奖励让许多人眼皮都膨胀起来。从被俘开始起，每天吃二顿稀饭——这个对大多数人来说还撑得住——从生下来就过着半饥半饱的日子的大有人在，但是连个咸萝卜之类的东西都没有，喝稀饭尿又多，吃不到盐，二天下来身子都软了。
+The promise of an extra reward made many eyes widen. Since their capture, they had received two meals of thin porridge a day. For men who had lived their whole lives on the edge of starvation, this was tolerable. But the lack of anything salty, like pickled vegetables, combined with the diuretic effect of the porridge, had left them feeling weak after just two days.
 
-　　“王田指挥得力，发二条。”这个奖励让王田兴奋的满脸放光，其他四个人都觉得有点酸溜溜的。多吃条咸鱼是小事，丢了面子才是大事，都盘算着晚上要狠狠的收拾几个磨洋工的家伙——杀鸡儆猴。
-[y003]: /characters/y003 "王洛宾"
-[y004]: /characters/y004 "展无涯"
-[y011]: /characters/y011 "罗铎"
+"For his excellent leadership, Wang Tian gets two fish." The reward made Wang Tian's face beam with excitement. The other four leaders looked on with envy. The extra fish was a small thing, but the loss of face was a major blow. They all began plotting to make an example of a few slackers in their own teams that evening.
+
+[y003]: /characters/y003 "Wang Luobin"
+[y004]: /characters/y004 "Zhan Wuya"
+[y011]: /characters/y011 "Luo Duo"
