--- a/_posts/2009-11-26-2-04000.md
+++ b/_posts/2009-11-26-2-04000.md
@@ -1,79 +1,79 @@
 ---
 layout: post
-title: 第四十节 思想动态
+title: "Chapter 40: Ideological Trends"
 category: 2
 path: 2009-11-26-2-04000.md
 tag: [normal]
 ---
 
-　　邬德的另外一个任务是防逃跑，一旦开始外出劳动，多半会有人尝试逃走，他必须完全杜绝这样的事情发生，一次成功的逃脱会给其他人类似的希望。
+Wu De's other task was to prevent escapes. Once the laborers started working outside, it was highly likely that some would try to flee. He had to completely eliminate this possibility, as a single successful escape would give hope to others.
 
-　　所以在开始外出劳动的之前，他向执委会要求，派给他看守俘虏的军事组员都得是特等射手，最好还配上瞄准镜和夜视镜。
+Therefore, before the outdoor labor began, he requested from the Executive Committee that the military group members assigned to guard the captives must be expert marksmen, preferably equipped with scopes and night vision goggles.
 
-　　“要这么强得人做什么？”何鸣觉得有些奇怪。
+"Why do you need such skilled people?" He Ming found it a bit strange.
 
-　　“发现有人逃走的时候可以一击必杀。”邬德解释说，制止的越干脆利落，越残忍无情，越能产生效果。等到恐惧度足够了，就不需要看守也行了。
+"To kill anyone who tries to escape with a single shot," Wu De explained. The more swift, decisive, and ruthless the suppression, the more effective it would be. Once the level of fear was high enough, guards would no longer be necessary.
 
-　　接着，他把那些说愿意入伙的人都打散了安插到各个劳工队去，吩咐如果有人谈论逃跑的事情就可以直接来找他报告。
+Next, he broke up the group of those who had expressed willingness to join and scattered them among the various labor teams, instructing them to report directly to him if they heard any talk of escape.
 
-　　他并不向这些人许诺什么，也不给什么好处，要想得到信任就得表现出卖身投靠的勇气来。
+He made no promises to these informants, nor did he offer any benefits. To gain his trust, they had to show the courage to fully commit to his side.
 
-　　大概是因为那场战斗给了许多人太强烈的印象，也或许是他们原来过得日子和现在相比相差无几，反正除了有人反映几个小地主富农在抱怨没人来赎他们，家里的农活没法做之外，没异常的情况。
+Perhaps it was because the battle had left such a strong impression on many, or perhaps because their former lives were not much different from their current ones, but aside from a few small landlords and rich peasants complaining that no one had come to ransom them and that their farm work was being neglected, there were no unusual reports.
 
-　　符不二因为腿上有伤，没有和其他人一起去当劳工，而是和其他伤员在帐篷里休养。每天除了换药就是吃饭，伙食也还不差，大米稀饭虽然稀，但是管够。看到几个海贼的白衣郎中每天进进出出的照看伤势，符不二还是很钦佩的：到底是医者父母心。无形中的害怕也少了许多。
+Fu Buer, due to a leg injury, was not sent to work with the others but was recuperating in a tent with the other wounded. His days consisted of changing his dressings and eating. The food wasn't bad; the rice porridge was thin, but there was enough of it. Seeing the "pirate" medics in their white coats coming and going every day to tend to the wounded, Fu Buer was quite impressed. "Doctors are like parents," he thought. His fear gradually subsided.
 
-　　受伤的俘虏原来有二三十个，有的没捱过手术后的恢复死了，有的伤很快就好了，便给打发到到劳工队去干活了。符不二的长工马蓬只是脚崴伤，很快就给送走了，这个长工过去符不二连正眼都不会看一眼，现在他走了反而觉得很留恋了。眼下，自己身边一个熟人都没有了。
+There had been twenty to thirty wounded captives initially. Some had died after surgery, while others recovered quickly and were sent to the labor teams. Fu Buer's long-term laborer, Ma Peng, had only sprained his ankle and was sent away soon after. In the past, Fu Buer wouldn't have given Ma Peng a second glance, but now that he was gone, he felt a sense of loss. He was now surrounded by strangers.
 
-　　又过得几天，马蓬却寻了个机会来看他。说自己正在海贼们做工，他现在不叫他们海贼了，而是恭恭敬敬的叫他们“首长们”。这词听得符不二很新鲜。马蓬现在每天伐木挖土。顿顿有白米稀饭吃，三天二头的还能吃到咸鱼。一天干活也就六个时辰——就是每天被逼着洗澡很烦，不过他也已经习惯了，总得来说日子还算过得去。听说海贼们给白米和鱼吃，这让符不二有点意外：他家给长工长年吃的都是番薯，要到农忙加犒劳的时候才会给米饭和咸鱼吃，虽然根本不和自己不搭界，他还是为海贼们的奢侈而痛心。
+A few days later, Ma Peng found an opportunity to visit him. He said he was now working for the pirates, whom he no longer called "pirates" but respectfully referred to as "the Chiefs." The term was new to Fu Buer. Ma Peng now spent his days felling trees and digging earth. He had white rice porridge for every meal and salted fish every two or three days. He worked for about six *shichen* (12 hours) a day. The only annoyance was being forced to bathe daily, but he had gotten used to it. All in all, life was tolerable. Hearing that the pirates provided white rice and fish surprised Fu Buer. At his own home, his long-term laborers were fed sweet potatoes year-round. Rice and salted fish were only given as a bonus during the busy farming season. Although it had nothing to do with him, he felt a pang of regret for the pirates' extravagance.
 
-　　马蓬还说了许多不可思议的事情，比如那自己会动的机器，一会时间就能自己做出几千几万块砖坯；还有台浑身冒烟，发出隆隆吼叫的东西，“首长们”不许他们靠近，据说那是一切的力量来源，就是要不断的添柴，一天用的柴比一村人做饭用的柴都多。其他还有装在四轮车上的锅灶，神奇的锯子，一下子就可以锯断一棵大树……
+Ma Peng also spoke of many incredible things, like the self-propelled machine that could make thousands of bricks in a short time, and another roaring, smoke-belching contraption that the "Chiefs" forbade them from approaching. It was said to be the source of all power, constantly needing to be fed firewood, consuming more in a day than a whole village used for cooking. There were also stoves mounted on four-wheeled carts and magical saws that could fell a large tree in an instant...
 
-　　他说得高兴，符不二听了也不怎么惊讶：他自己这些日子也见了许许多多新奇的事情。对海贼们的新鲜玩意已经有了一定的思想准备。
+As Ma Peng spoke excitedly, Fu Buer was not particularly surprised. He himself had seen many strange things these past few days and was mentally prepared for the pirates' novelties.
 
-　　“……首长说了，干活干得好的，如果愿意留下就可以转职工。”
+"...The Chief said that those who work well and are willing to stay can become 'staff members'."
 
-　　“职工？不就是当海贼么。”
+"'Staff members'? Isn't that just being a pirate?"
 
-　　“不是当海……贼，”马蓬小声的说“当那个还不够资格。叫职工，小人也不知道怎么写得，反正就是一天吃三顿，顿顿有荤得，每月还能休息一天什么的……”马蓬有点羡慕的神情。
+"Not being a... pirate," Ma Peng whispered. "We're not qualified for that yet. It's called being a 'staff member.' I don't know how to write it, but it means three meals a day, with meat at every meal, and one day off a month..." Ma Peng's face showed a hint of envy.
 
-　　“呔！你想从贼？”符不二眼看着自己的长工就要堕入造反的深渊，马蓬的生死存亡他倒是不怎么在乎，只是怕自己的劳动力要少一个，赶紧提醒他这是条险恶的路。
+"Hey! You want to join the rebels?" Fu Buer saw his laborer on the verge of falling into the abyss of rebellion. He didn't much care about Ma Peng's life or death, but he was afraid of losing a worker. He quickly reminded him that it was a dangerous path.
 
-　　“我是不敢。老爷说得是，那是要杀头的。可听说有人愿意。再说眼下县里的太爷都拿他们没辙，我们小民有什么办法。”马蓬给海贼们做了十来天的工，似乎嘴巴也灵活起来了，“反正都是干活……”
+"I wouldn't dare. As you say, master, that's a beheading offense. But I've heard some are willing. Besides, even the county magistrate can't do anything about them now. What can we common folk do?" After working for the pirates for about ten days, Ma Peng seemed to have become more articulate. "It's all just work anyway..."
 
-　　“马蓬，你这个可是存了胡涂心思！”符不二训斥道，“朝廷大兵一到，还不是化为灰烬！你依附海贼，到时候连自己落个从贼的名头！”
+"Ma Peng, you're thinking foolishly!" Fu Buer scolded. "When the imperial army arrives, they'll all be turned to dust! If you side with the pirates, you'll be branded a rebel!"
 
-　　马蓬张了张嘴，大概不知道说什么好。
+Ma Peng opened his mouth but didn't seem to know what to say.
 
-　　符不二却乘机打听家里有没有消息，马蓬说他自己一直在干活，没看到村里来人。而且如今海贼们的开工的地方很多很大，他经常被赶着这边做几天那边做几天的，都快闹不清地方了。符不二心里很着急，想就算要勒索赎金，总也得派人去说票吧，怎么海贼们连个声音都没有？
+Fu Buer took the opportunity to ask if there was any news from his family. Ma Peng said he had been working constantly and hadn't seen anyone from the village. Moreover, the pirates' work sites were now numerous and vast, and he was often moved from one place to another, losing track of his location. Fu Buer was anxious. Even if they wanted a ransom, shouldn't they have sent someone to negotiate? Why was there no word from the pirates?
 
-　　马蓬因为还有活干，赶紧走了。符不二腿上的伤已经差不多都好了，能够走动了。遗忘他不敢出去，怕给海贼们看到了当他要跑就砍了。如今看到马蓬进出很自由，便拿个棍子当拐杖，从帐篷里出去转转，帐篷四周都是铁丝网，他一看到这玩意就一阵哆嗦，那天打仗的时候，血淋淋的尸体挂在铁丝网上的情景实在太恐怖了，让他一直不能忘记。
+Ma Peng had to get back to work and left quickly. Fu Buer's leg had mostly healed, and he could walk. He had been afraid to go out, fearing the pirates would see him and cut him down for trying to escape. But seeing Ma Peng moving about freely, he used a stick as a crutch and ventured out of the tent. The tent was surrounded by barbed wire. The sight of it made him shudder. The memory of the bloody bodies hanging on the wire during the battle was too horrific to forget.
 
-　　铁丝网外面有一座木头的塔楼，下面百无聊赖地站着了一个小海贼，背着上了短剑的鸟铳，这玩意的威力符不二是见识过得，打起来密得像下雨，枪声一响，身边的人就死一片。这么厉害的火器，别说他们这样的民团，就是官军来也够呛。不过符不二也清楚指望官军来解救他们是梦想，大明官军才懒得来理会他们这些百姓的死活，真要来剿匪，只怕第一个就把他们这些肉票砍了头去冒功领赏——他到广州去的时候，这样的事情听说了不知道多少——“客军如匪”。
+Outside the wire was a wooden watchtower, with a young pirate standing bored at its base, a musket with a bayonet slung over his back. Fu Buer had witnessed the power of these weapons. When fired, the shots were as dense as rain, and with each volley, a swath of men around him would fall. With such powerful firearms, not only would a militia like theirs be no match, but even the official army would have a tough time. However, Fu Buer also knew that hoping for the official army to rescue them was a dream. The Ming army couldn't be bothered with the lives of common people like them. If they did come to suppress the "bandits," they would probably be the first to be beheaded, their heads presented for rewards. He had heard countless such stories during his trips to Guangzhou—"guest armies are like bandits."
 
-　　忽然空气中传来了一声怪异的吼叫声，又像是爆竹爆炸的声音。接着是隆隆的轰鸣声，循声望去，只见一个红色的钢铁怪兽在咆哮，喷出污浊的黑烟，以不可思议的力量啃噬着地面，眼前的景象即使在最可怕的噩梦中都没有看到过，符不二的脸色苍白，差点跌下去。
+Suddenly, a strange roar filled the air, like the explosion of a firecracker, followed by a rumbling thunder. Looking towards the sound, he saw a red iron monster roaring, spewing black smoke, and chewing at the ground with incredible force. The sight was more terrifying than his worst nightmares. Fu Buer's face turned pale, and he nearly collapsed.
 
-　　眼看着铁板咯吱的作响，这个庞然大物缓缓地移动着，接着一声嘶吼，一个巨大的铁铲猛得从土里举了起来，泥土和碎石象瀑布一样的洒落在四周，一切都显得那么惊心动魄。
+He watched as the iron plates creaked and the behemoth moved slowly. Then, with a roar, a giant iron shovel lifted from the ground, and dirt and rocks cascaded around it like a waterfall. The scene was breathtaking.
 
-　　符不二惊讶的说不出话来，这样的力量，有什么能抵挡？别说琼州府的一千多官军，就是调集几省人马会剿，又能如何？他们有这样大的力量，在这里大兴土木，不是为了长久居住又是为了什么？
+Fu Buer was speechless with astonishment. What could possibly stand against such power? Not the thousand-odd government troops of Qiongzhou Prefecture, not even the combined forces of several provinces. With such power, and engaging in such large-scale construction, what else could they be doing but preparing for a long-term stay?
 
-　　想到这里，他的脑子变得很混乱，到底是福是祸也闹不清了，一时间蹲在地上，茫然无措了。
+At this thought, his mind became a chaotic mess. He couldn't tell if this was a blessing or a curse. He squatted on the ground, lost and bewildered.
 
-　　邬德拿着最新的一期《俘虏思想动向》稿子去向执委会汇报。执委会对这批俘虏期待很高，想把他们作为未来政权建设的种子，所以对这些人思想状态要求每周一都做出汇报来，以便做出相应的政策调整。
+Wu De took the latest issue of the "Captive Ideological Trends" report to the Executive Committee. The committee had high hopes for this group of captives, seeing them as the seeds for future political construction. Therefore, they required a weekly report on their ideological state to make corresponding policy adjustments.
 
-　　执委会大楼——虽然实际上是做简易房小楼，但是大家还是习惯性的叫它办公大楼，以示气派——现在已经完全变样了，四面的铁丝网拆除了，修建起了高高的围墙，木质的双开大门前设了岗，办公楼两翼新修了两排平房——俘虏里既然有泥水匠，修几间老式的砖木架构瓦房自然不成问题。大院的地面全部铺上了青砖，还一左一右的修了二个花坛，院子里停着一辆北京212，还零放着几辆摩托车和自行车。乍一看，很像60－70年代某个县城的县委大院。
+The Executive Committee building—though in reality a simple prefabricated building, everyone habitually called it the "office building" for grandeur—had been completely transformed. The surrounding barbed wire had been removed and replaced with high walls. A guard post was set up in front of the wooden double doors. Two rows of single-story houses had been newly built on either side of the office building—since there were masons among the captives, building a few old-style brick-and-wood tile-roofed houses was no problem. The courtyard was paved with green bricks, and two flowerbeds had been built on either side. A Beijing 212 jeep was parked in the yard, along with a few scattered motorcycles and bicycles. At first glance, it looked very much like a county party committee compound from the 1960s or 70s.
 
-　　邬德没有进大楼，直接进了东面的一间瓦房，门前的白底黑字牌上面用端正的美术字写着“文印室”，这里就是执委会编辑印刷文件和各种内部刊物的地方。
+Wu De did not enter the main building but went directly into a tile-roofed house on the east side. The white sign with black characters on the door read "Printing Room" in neat artistic script. This was where the Executive Committee edited and printed documents and various internal publications.
 
-　　这种内部刊物从执委会搬到百仞滩就开始编辑了。虽然丁丁吵着要办临高时报，但是执委会一直以时机不到为名拒绝了他的请求，而是让他负责搞内部刊物。这类内部刊物从全体穿越者穿越到只限执委会传阅都有。《俘虏思想动向》就属于只限执委会和理论政策组传阅的材料，每期只印五份。
+These internal publications had been edited since the Executive Committee moved to Bairen Beach. Although Ding Ding had been clamoring to start the "Lingao Times," the Executive Committee had consistently rejected his request on the grounds that the time was not yet right, instead putting him in charge of internal publications. These publications ranged from those for all transmigrators to those restricted to the Executive Committee. "Captive Ideological Trends" was a restricted material for the Executive Committee and the theoretical policy group, with only five copies printed per issue.
 
-　　文印室里黑洞洞的，因为要节约用电，除非工作需要，否则不开灯。屋子很大，里面有一台快速油印机，一张从船上取下来的大桌子上摊着蜡纸、钢板和铁笔，角落里是二台电脑和几台爱普生的24针打印机，装白纸的箱子和印好的文件堆在墙角。
+The printing room was dark. To save electricity, the lights were kept off unless necessary for work. The room was large, containing a high-speed mimeograph machine. A large table taken from the ship was covered with wax paper, steel plates, and styluses. In the corner were two computers and several Epson 24-pin printers. Boxes of white paper and stacks of printed documents were piled against the wall.
 
-　　屋子里没有人，邬德随手拿起桌子上的一张清样，像是张单开的小报，头版有两个歪歪扭扭的斗大毛笔字写着蝌蚪文般的文字，仔细看，原来是《临高快讯》，下面还有落款：席亚洲题。
+The room was empty. Wu De casually picked up a proof sheet from the table. It looked like a single-sheet tabloid. The front page had two large, crooked, tadpole-like characters written with a brush. On closer inspection, it was "Lingao Express," with a signature below: "Inscribed by Xi Yazhou."
 
-　　席亚洲的脑袋看起来已经好了，都给刊物题字了。邬德看了起来，该报纸大篇幅报道了“第一次反围剿”的胜利，夸张的报道当地官府出动了三千人的大军，但是在我天军神威的打击下，仅半个时辰便全部被消灭。虽然署名是本报军事评论员，但是那类似战棋游戏说明一样的文体，显然就是出自在D日不幸负伤的席亚洲之手。
+Xi Yazhou's head seemed to have healed; he was already inscribing for publications. Wu De began to read. The newspaper reported in great detail on the victory of the "First Counter-Encirclement Campaign," exaggerating that the local government had dispatched a large army of three thousand men, but under the divine might of our heavenly army, they were all annihilated in just half a *shichen* (one hour). Although the author was listed as the paper's military commentator, the wargame-like writing style was clearly the work of Xi Yazhou, who had been unfortunately wounded on D-Day.
 
-　　然后是一篇社论，署名：本报特约评论员。评论道：反动的明朝政府必将被我英明伟大的穿越党彻底消灭。
+Next was an editorial, signed: "Special Commentator for this Newspaper." It commented: "The reactionary Ming government will inevitably be completely eliminated by our wise and great Transmigration Party."
 
-　　后是一篇理论文章，介绍马克思主义，当然，这位马先生成了出生于万历年间的一位隐士。落款是杜雯。不过这文章虽然很长，还列举了许多数字，邬德却始终没看明白写得到底是什么。估计连马克思自己看了也不知道。
+Following that was a theoretical article introducing Marxism. Of course, this Mr. Ma had become a hermit born in the Wanli era. The author was Du Wen. However, although the article was long and cited many numbers, Wu De could not understand what it was about. He estimated that even Marx himself wouldn't know if he read it.
 
-　　报屁股上，又是一篇文章《临高农民的血泪控诉》，里面写了许多农民的悲惨遭遇。邬德觉得很眼熟——这不就是小郭审问俘虏之后抄送给他的《审俘记要》里摘抄来的东西么。真是天下文章一大抄，里面还添油加醋的增加了许多内容，其想象力简直令人发指。作者很自觉的没有署名。
+At the bottom of the page was another article, "The Bloody Tears and Accusations of the Lingao Peasants," which described the tragic experiences of many peasants. Wu De found it very familiar—wasn't this just excerpts from the "Summary of Captive Interrogations" that Guo Yi had sent him? It was truly a case of "all articles under heaven are plagiarized." Many details had been added with embellishments, and the imagination was simply outrageous. The author had consciously chosen not to sign their name.
