--- a/_posts/2009-11-27-2-04100.md
+++ b/_posts/2009-11-27-2-04100.md
@@ -1,105 +1,108 @@
 ---
 layout: post
-title: 第四十一节 行款
+title: "Chapter 41: Negotiations"
 category: 2
 path: 2009-11-27-2-04100.md
 tag: [normal]
 ---
 
-　　“老邬，你来了！”正看着，周洞天从外面进来了，他穿的作训服上都是油墨渍，其实他在穿越前当过消防干事，后来是一名司法工作者，不过因为他很熟悉印刷事务，便成了这个文印室的头头，屋子里的多数设备也是他出钱购置的。
+"Old Wu, you're here!" Just as he was looking, Zhou Dongtian came in from outside, his work uniform stained with ink. Before the transmigration, he had been a fire safety officer and later a judicial worker. However, his familiarity with printing had made him the head of this printing room, and he had personally purchased most of the equipment.
 
-　　“怎么，出报纸了？”邬德指着那清样。
+"What, publishing a newspaper?" Wu De pointed to the proof sheet.
 
-　　“对，执委会已经批准了丁丁的建议，办一张报纸，不过只是不定期的小报。第一期印五十份。”
+"Yes, the Executive Committee approved Ding Ding's proposal. It's just an irregular tabloid for now. We'll print fifty copies of the first issue."
 
-　　“我觉得这报纸定位不对头啊，准备给谁看？”
+"I don't think the positioning is right. Who is this for?"
 
-　　“你说我们能不知道马克思么？”
+"You think we don't know about Marx?"
 
-　　“既然给当地人看，怎么用简体字？而且，执委会有没有考虑识字率的问题？”邬德觉得这真是个笑话，就说他管理的138个俘虏吧，除了一个张兴教能读能写，只有二三个小地主还识几个字，文盲率高达到95％以上，这么一个社会环境，印报纸不是多余么。
+"If it's for the locals, why use simplified characters? And has the Executive Committee considered the literacy rate?" Wu De thought it was a joke. Among the 138 captives he managed, only Zhang Xingjiao could read and write. A couple of small landowners knew a few characters, but the illiteracy rate was over 95%. In such an environment, wasn't printing a newspaper pointless?
 
-　　“马上就要对你的劳工队开始扫盲了，”周洞天指了下那边的电脑，“文教组已经出了扫盲教材的第一稿出来，我们还准备搞石印，做些识字卡片。”
+"We're about to start a literacy campaign for your labor teams," Zhou Dongtian pointed to a computer. "The Culture and Education Group has already drafted the first version of the literacy textbook. We're also planning to use lithography to make flashcards."
 
-　　“还真想得出。”
+"They really are full of ideas."
 
-　　“都是丁丁的想法，”周洞天嘿嘿地笑着，“这记者真会想，野心很大，除了办报纸，还想搞教材出版。”
+"It's all Ding Ding's doing," Zhou Dongtian chuckled. "That reporter has big ambitions. Besides the newspaper, he wants to get into textbook publishing."
 
-　　“有想法就是好，对了，这是稿子，尽快帮我印出来吧。”
+"Ideas are good. Anyway, here's my manuscript. Please print it for me as soon as you can."
 
-　　“你这点东西，我拿打印机给你打蜡纸就能出来，等一下好了。”说着就去开电脑，邬德的稿子是写在电脑上的，用无线网络直接传送到OA上，连电脑打字的功夫都省却了。
+"This little thing? I can just use the printer to cut a stencil for you. It'll just be a minute." He went to turn on the computer. Wu De's manuscript was already on the network, sent directly to the office automation system, saving him the trouble of even typing it out.
 
-　　“既然有电脑网络了，还印什么文件呢？文牍主义！”邬德感慨着。
+"Since we have a computer network, why are we still printing documents? Such bureaucracy!" Wu De lamented.
 
-　　“大概是为了给日后留下文字的存档吧，电脑总有一天是要坏得。”周洞天调整着机器，夹上蜡纸，“再过个十年，估计这些东西都得手写了。我还带了一台老式的中文打字机，机器坏了就指望它打蜡纸了。”
+"Probably to leave a paper trail for the archives. The computers will break down eventually." Zhou Dongtian adjusted the mimeograph machine and inserted the wax paper. "In another ten years, we'll probably have to handwrite everything. I brought an old-fashioned Chinese typewriter, just in case. If the machines fail, we'll have to rely on that to cut stencils."
 
-　　油印好材料，照例要留一份给情报资料组存档，他直接去找执委会的几名主要领导谈话了。
+After printing the materials, he followed protocol and left a copy for the intelligence archives, then went to speak directly with the key leaders of the Executive Committee.
 
-　　“你是说俘虏不太安心？”[文德嗣][y002]问。
+"You're saying the captives are restless?" [Wen Desi][y002] asked.
 
-　　“是的，而且有些人恐怕会一直不安心。”邬德指着自己的动态报告，“根据最新的报告，那些自己有宅地的小地主、富农和中农，因为马上要农忙了，不能回去干活，又担心家人，所以一直都有浮躁的情绪。”
+"Yes, and I'm afraid some will remain so." Wu De pointed to his report. "According to the latest intelligence, the small landowners, rich peasants, and middle peasants with their own property are agitated. The busy farming season is approaching, they can't go home to work, and they're worried about their families."
 
-　　“这些人应该不多。”
+"There shouldn't be too many of them."
 
-　　“没错，但是一般的佃户也有类似的问题，他们不收粮食就缴不了租，自己和家人的生活没有保证。”
+"True, but the tenant farmers have similar concerns. If they can't harvest their crops, they can't pay their rent, and their families' livelihoods are at risk."
 
-　　“嗯，嗯。”
+"Mm-hmm."
 
-　　“真正觉得那里都可以活得，只有那些没有家累的赤贫户或者长工。”
+"The only ones who seem content to live anywhere are the destitute with no family ties, or the long-term hired hands."
 
-　　“这么说，愿意归附我们的人不多。”[文德嗣][y002]有些气馁。
+"So, not many are willing to join us," [Wen Desi][y002] said, sounding discouraged.
 
-　　“是的，其实我们对穷人是有吸引力的，特别是我们推出的‘职工’待遇之后。起码对原来扛活的人来说给我们干比给老财们干好多了。可是对于有一点家室产业的佃户、贫农，可就未必了——他们更在乎的是‘安稳度日’——其实就是这些人对‘红旗能打多久’有顾虑。”
+"Correct. We are attractive to the poor, especially with the 'staff' benefits we're offering. For the former hired laborers, working for us is far better than for the old landlords. But for tenant farmers and poor peasants with a little property and family, it's a different story. They care more about a 'stable life.' They're the ones worried about 'how long the red flag will fly.'"
 
-　　“在我们没有取得更大的胜利或者合法的地位之前，恐怕这个顾虑没法消除。”[萧子山][y001]也显得很失望。
+"Until we achieve a greater victory or some form of legitimacy, I'm afraid that concern won't go away," [Xiao Zishan][y001] added, equally disappointed.
 
-　　“就算有顾虑，也得推行下去。”[文德嗣][y002]考虑了一下，“还记得预定的方针么，‘明灯效应’，只要大家看到为我们效力能活得更好，自然而然的就会倾向我们了——老百姓还是看眼前的比较多一些。”
+"Even with their concerns, we have to press on," [Wen Desi][y002] mused. "Remember our guiding principle? The 'beacon effect.' As long as people see that serving us leads to a better life, they will naturally gravitate towards us. The common folk tend to focus on what's right in front of them."
 
-　　“这个我赞同，只要能切切实实的给好处，老百姓是不会忘记的。”
+"I agree. As long as we provide tangible benefits, the people won't forget."
 
-　　“还有，那八个黎民俘虏，现在还押在俘虏营里，没有编入劳工队。执委会打算怎么处理他们？”
+"Also, what about the eight Li captives? They're still in the POW camp and haven't been assigned to a labor team. What does the Executive Committee plan to do with them?"
 
-　　“我们正准备以他们为突破口，和南面的黎侗交通起一定的关系。”[萧子山][y001]解释道，“慕敏正做这项工作。这几天就会出结果了。”
+"We're planning to use them as a breakthrough to establish contact with the Li and Dong peoples to the south," [Xiao Zishan][y001] explained. "Mu Min is handling it. We should have results in a few days."
 
-　　言下之意就是此事不是你过问的范畴，邬德点了点头。正说着话，[文德嗣][y002]的小灵通响了起来，有人在电话里说了些什么，[文德嗣][y002]说了句：“让他们先等着，好好招待。我们这就来。”对邬德说：“有当地人来拜访我们了。”
+The implication was clear: it wasn't Wu De's concern. He nodded. Just then, [Wen Desi][y002]'s PHS phone rang. After a brief conversation, [Wen Desi][y002] said, "Have them wait. Treat them well. We'll be right there." He turned to Wu De. "We have some local visitors."
 
-　　“哦？”邬德来了兴趣。
+"Oh?" Wu De was intrigued.
 
-　　“是为了俘虏的事情，你和我们一起去吧，对了，把熊卜佑也带上。还有那谁，当地的翻译，都叫来。”
+"It's about the captives. You should come with us. And bring Xiong Buyou. Also, what's-his-name, the local translator. Get them all."
 
-　　“好，我这就去办。”
+"Right, I'll see to it."
 
-　　自从县里的两路反攻惨败之后，整个临高县城里一度又情势紧张起来。听逃回来的乡勇说海贼们火器十分厉害，一打就是死一片，连本县赫赫有名的黄家寨的团练都被打败了，连黄守统本人都受了重伤，被直接抬回黄家寨去了。城里人心惶惶，缙绅们有人已经在往偏远处的亲戚或者自家的庄寨上转移财物和人口，还有的则慌称家里有事或者身体不适，纷纷告退回家去了。连躲在城里的难民也有想出城的——风闻这群短毛的海贼要来洗城报仇的。
+***
 
-　　折腾了几天，看髡贼们没有要来攻城的意思，官绅们才惊魂稍定。因为损失太大，一时间内部开始吵吵嚷嚷起来了。本来以为谋划的天衣无缝的进攻不光彩的失败，使得刘进士的所谓讨贼之策被证明根本无用。有人在风言风语的说刘进士是秀才谈兵，上误朝廷下误乡梓，把个本来就身体不好的刘大霖气了个半死——一个月来劳心劳力的落了这么个下场。他身体也不好，就此告退回家休养起来。
+After the disastrous failure of the county's two-pronged counterattack, tension once again gripped Lingao. The returning militiamen spoke of the pirates' terrifyingly powerful firearms, which could kill swathes of men with a single volley. Even the renowned militia of the Huang Family Village had been crushed, and their leader, Huang Shoutong, was seriously wounded and carried back to his village. Panic spread through the town. Some of the gentry began moving valuables and family members to relatives in remote areas or to their own fortified manors. Others feigned illness or urgent family matters and fled home. Even the refugees who had sought shelter in the town now wanted to leave, fearing the short-haired pirates would come to sack the city in revenge.
 
-　　吴县令即生气又不便阻拦，每天只在花厅生闷气，又担心。海贼登陆已将近一个月，到现在也没看他们有退走的意思，缙绅们对自己也失去了信任，城里的人心都散了，髡贼们要是来攻城，恐怕那些弓手乡勇立马就会一哄而散。至于府城那边，到现在除了来个书子，要他“谨守城池”之类的废话之外，便是提醒他朝廷秋粮开征在即，要他全力督责此事。
+After a few days, when it became clear the "Kun" bandits had no intention of attacking, the officials and gentry breathed a collective sigh of relief. The heavy losses, however, sparked internal squabbles. The ignominious failure of the supposedly perfect plan proved that Scholar Liu's strategy was useless. Rumors spread that he was an armchair general, misleading both the court and the local populace. The gossip infuriated the already frail Liu Dalin, who had worked tirelessly for a month only to end up like this. Citing his poor health, he retired to his home to recuperate.
 
-　　“征粮，征粮，如今一团糟，还征什么粮！”吴明晋一团愤懑。想来想去，也只好去求教师爷了。
+Magistrate Wu was furious but couldn't stop him. He spent his days sulking and worrying. It had been nearly a month since the pirates landed, and they showed no sign of leaving. The gentry had lost faith in him, and morale in the city had collapsed. If the "Kun" bandits attacked now, the archers and militiamen would likely scatter instantly. As for the prefectural government, they had sent nothing but a letter with useless platitudes like "defend the city diligently," and a reminder that the autumn grain tax was due, urging him to see to its collection.
 
-　　这位王师爷名兆敏，广东人，在省内的各州县幕中多年，对地方上的一套很熟悉。
+"Collect grain, collect grain! Everything is a mess, what grain is there to collect!" Wu Mingjin fumed. He had no choice but to consult his private secretary.
 
-　　王师爷沉吟了半日，低声道：“东翁，我等即无力驱贼，唯有行款了。”
+This Secretary Wang, named Zhaomin, was a Guangdong native who had served in various prefectures and counties for years and was well-versed in local politics.
 
-　　“行款？”吴县令吓了一下，差点没跳起来大骂荒谬。但他毕竟是在地方官场浸淫过多年的，马上沉住了气。
+After a long pause, Secretary Wang spoke in a low voice. "Your Excellency, since we cannot drive the bandits away, our only option is to negotiate."
 
-　　“行得通么？”
+"Negotiate?" The magistrate was so startled he almost jumped up and shouted "Absurd!" But years in officialdom had taught him to keep his composure.
 
-　　王师爷捋起了胡子，笑道：“这也算是权宜之计。眼前最要紧之事乃是秋粮！只求得把这一季的秋粮收上去，自然就是天下太平。海贼么，闽粤各省都在闹，难道就我们这里闹不得？”
+"Will it work?"
 
-　　“是，是，老先生说得是。”吴县令有种豁然开朗的感觉，忽然他眉头一皱，“只是这事情，怕是瞒不过上宪，还有厂卫们——”说着他下意识的朝四周看了一眼。
+Secretary Wang stroked his beard and smiled. "It is an expedient measure. The most pressing matter is the autumn grain. If we can just get this season's harvest collected, all will be peaceful. As for pirates, they are rampant in Fujian and Guangdong. Why not here?"
 
-　　“东翁不必多虑，官场上的事情，多一事不如少一事。只要秋粮入库，县城不失，府台大人理这些作甚？他人亦是。”王师爷小声道，“以髡贼们之势，要取这县城早就取了，何必在百仞滩筑营居住？他们在本县即不掳掠又不杀人，颇有仁义之风，我们就算是买个平安，对付过去再说。”
+"Yes, yes, you are right, old sir." The magistrate felt a wave of relief, but then he frowned. "But I fear this cannot be hidden from my superiors, or from the secret police..." He glanced around nervously.
 
-　　“有理有理。”吴明晋连连点头，“不过此事毕竟非同小可——”
+"Your Excellency need not worry," Secretary Wang whispered. "In official matters, less is more. As long as the grain is in the granaries and the county seat is secure, why would the Prefect concern himself with this? The same goes for others. Given the 'Kun' bandits' strength, they could have taken the city long ago. Why build a camp at Bairen Beach? They haven't plundered or killed anyone in the county; they seem quite benevolent. We can consider this buying peace, just to get by for now."
 
-　　“东翁放心，”王师爷一脸成竹在胸的神情，“恐怕急着要想髡贼们行款的，不是我们，而是那些士绅们。”说着他压低了声音，又说了许多话。
+"Reasonable, very reasonable," Wu Mingjin nodded. "But this is no small matter—"
 
-　　果然绅士们担心着自己的收成，有的因为自己村寨里有人在“剿匪”时下落不明，都想着和海贼们去联络，这边王师爷稍稍一暗示，大家就自顾自的去备办这些事情了。
+"Rest assured, Your Excellency," Secretary Wang said with confidence. "I suspect it is not we who are most anxious to negotiate with the 'Kun' bandits, but the gentry." He lowered his voice and continued speaking.
 
-　　经过商量，士绅们派去的代表是县里一个破落地主，名叫张兴福的，因为爹是个赌棍，把家都败得差不多了，留给他的不过百十亩坡地，纯粹看天吃饭。因为他老婆的娘家和刘香家有一点亲戚关系，和在这附近活动的各路人马都说得上些话，常受人之托同海贼们打交道，讲斤两，说票之类的事情常由他出面。虽然各方都对他不完全信任，但遇事还不得不找他在中间说话。他自己也利用这种身份弄点儿外快，得些酬劳。
+And so it was. The gentry, worried about their harvests and with some of their own men missing after the "bandit suppression" campaign, were already eager to establish contact with the pirates. A subtle hint from Secretary Wang was all it took for them to begin making their own arrangements.
 
-　　随同他一起来的人，不是某家的管事就是谁家的远房同宗，士绅们怕自己来了给海贼扣留了勒索，都派些不要紧的人来。都带着礼物，抬着猪、羊和礼物，拿着帖子去拜见，帖子上按照当时士大夫阶层平辈交际的习惯，谦称为“侍生”。
+After some discussion, the gentry chose as their representative a down-on-his-luck landlord named Zhang Xingfu. His gambler father had squandered the family fortune, leaving him with only a hundred-odd *mu* of hillside land that depended entirely on the weather. However, his wife's family had a distant connection to the pirate leader Liu Xiang, which gave him some sway with the various groups active in the area. He was often called upon to negotiate with pirates over ransoms and other matters. Though no one fully trusted him, they had no choice but to use him as an intermediary. He, in turn, used this position to earn a little extra on the side.
 
-　　出县城走不到半个多时辰，远远得望见前面有土垒和塔楼，便知道海贼们的大营到了。这些海贼登陆一个多月了，众人是只闻其名，连声都没听过。许多人都知道他们片刻之间就把本县最强的团练打一蹶不振，连黄守统都被打倒。不过听闻海贼们纪律尚好，多少还让他们心安。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
+Accompanying him were stewards and distant relatives of the gentry, who were too afraid of being captured and held for ransom to go themselves. They came bearing gifts of pigs, sheep, and other presents, along with formal calling cards. On the cards, following the custom of the scholar-gentry class when addressing peers, they humbly referred to themselves as "your students."
+
+Less than an hour's walk from the county town, they saw earthen ramparts and watchtowers in the distance. They had reached the pirates' main camp. The pirates had been ashore for over a month, but the locals had only heard their name, never even their voices. They knew the pirates had crushed the county's strongest militia in an instant, felling even Huang Shoutong. But the rumors of their good discipline offered a small measure of comfort.
+
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
