--- a/_posts/2009-11-3-2-01700.md
+++ b/_posts/2009-11-3-2-01700.md
@@ -1,101 +1,101 @@
 ---
 layout: post
-title: 第十七节 百仞滩（一）
+title: Section 17: Bairen Tan (Part 1)
 category: 2
 path: 2009-11-3-2-01700.md
 tag: [normal]
 ---
 
-　　“薛，我有个很不好的感觉……”郭逸把他的发现一五一十的说给了他听，“——我不知道该怎么解释这一切，这要是他们安排，演出水平够得奥斯卡奖了。”
+"Xue, I have a very bad feeling..." Guo Yi told him everything he had discovered. "--I don't know how to explain all this. If they arranged it, their acting is Oscar-worthy."
 
-　　“你说的是，要取我们的性命，这样做没意义。如果只是想演戏让我们相信，代价又太大。”
+"You're right. It doesn't make sense to do this just to kill us. If it's just an act to make us believe, the cost is too high."
 
-　　外面的雨下得很大，两个人沉默着，看这水珠沿着防水布流到脚下的乱石堆里。不知道说什么好，一种被抛弃感攥住了他们，仿佛天地间就只剩下了自己——24小时里发生了太多无法解释的事情。
+The rain was pouring outside. The two of them were silent, watching the water droplets flow down the waterproof cloth and into the pile of rocks at their feet. They didn't know what to say. A sense of abandonment gripped them, as if they were the only ones left in the world. Too many inexplicable things had happened in the last 24 hours.
 
-　　“不是演戏。”本来睡着的萨琳娜说，她已经醒了过来，扶着石头坐了起来。
+"It's not an act," said Salina, who had been sleeping. She had woken up and was sitting up, leaning against a rock.
 
-　　“你睡着好了。”薛子良立马绅士起来，“你的内脏好像受了震荡，多休息。”
+"You should rest." Xue Ziliang immediately became a gentleman. "Your internal organs seem to have suffered a shock. Get more rest."
 
-　　“没关系……”萨琳娜的中文说得有些拗口，但是还算流利，“郭，你怀疑是有道理的，”她喘了一口气，“去检验尸体的时候，有没有内裤？”
+"It's okay..." Salina's Chinese was a bit awkward, but still fluent. "Guo, your suspicion is reasonable," she gasped for breath. "When you examined the body, did he have underwear?"
 
-　　郭逸想我又不是变态，青天白日的扒男尸的裤子作甚？
+Guo Yi thought, *I'm not a pervert. Why would I strip a male corpse in broad daylight?*
 
-　　“郭，古代的人是没有内裤的……”萨琳娜似乎有些萎顿，“特别是穷人。”
+"Guo, people in ancient times didn't wear underwear..." Salina seemed a little weak. "Especially the poor."
 
-　　“这个做不得准吧？”郭逸严重的怀疑。他回想起来，似乎搜东西的时候是没有发觉他们有内衣，至于是不是有内裤就不知道了。
+"Is that reliable?" Guo Yi was seriously skeptical. He recalled that he hadn't noticed any underwear when searching their belongings, but he didn't know if they had any.
 
-　　“假设他们是现代人装扮的，策划的人不可能连内裤问题都想到。”她稍微停了一下，对薛子良说：“雨停了我们回过去，看下尸体。”
+"Assuming they are modern people in disguise, the planners couldn't have thought of the underwear issue." She paused for a moment and said to Xue Ziliang, "When the rain stops, let's go back and look at the body."
 
-　　“不，”薛子良说，“万一敌人返回来，我们没体力再和他们打一仗了——我去把尸体背一具回来。”
+"No," Xue Ziliang said. "If the enemy returns, we don't have the strength to fight them again. I'll go and bring a body back."
 
-　　“我和你一起去。”
+"I'll go with you."
 
-　　“不，你在这里留守，萨琳娜现在没有抵抗的能力。”薛子良一摆手，“我去去就来。”说罢披了雨布钻了出去。
+"No, you stay here and guard. Salina has no ability to resist right now." Xue Ziliang waved his hand. "I'll be right back." He put on his rain gear and went out.
 
-　　一时间石窟里就剩下了郭逸和萨琳娜，小郭第一次和大洋马距离这么近，一股浓烈的香水味夹杂血腥气，又有一些异味，有点象野兽的气味……混合的气息让他浑身不自在。平心而论，凑近了的话萨琳娜这样的白种女性并不好看，皮肤粗糙，还有些疙疙瘩瘩的，但是那丰满又凹凸有致的身材，水汪汪的蓝色眼睛，乌黑的长睫毛……还是让他心头小鼓乱敲。要在原来的环境里他是不敢想的：身为一个普通的、非领导干部的安全人员，工作的敏感性使他不能和外籍人士有许多私交——除非是任务。眼下四面不靠的环境让他的组织性纪律性都开始摇摇欲坠……很想和萨琳娜搭讪几句……
+For a moment, only Guo Yi and Salina were left in the cave. It was the first time Little Guo was so close to a foreign woman. A strong scent of perfume mixed with the smell of blood, and some other odor, a bit like the smell of a wild animal... The mixed scent made him feel uncomfortable all over. To be honest, up close, a Caucasian woman like Salina wasn't very good-looking. Her skin was rough and a little bumpy, but her full and curvy figure, watery blue eyes, and long black eyelashes... still made his heart pound. He wouldn't have dared to think about it in his original environment. As an ordinary, non-leading security officer, the sensitivity of his job prevented him from having much private contact with foreigners—unless it was a mission. The current isolated environment made his sense of organization and discipline begin to waver... He really wanted to strike up a conversation with Salina...
 
-　　“郭，可以帮我拿个背包靠一下吗？”萨琳娜主动开口了，“我很累。”
+"Guo, can you help me get a backpack to lean on?" Salina spoke first. "I'm very tired."
 
-　　“哦，”小郭怔了一下，“好的。”从边上拖过背包，帮她靠在身下，借机又扶了一下她的肩头——肩膀好圆润……
+"Oh," Little Guo was stunned for a moment. "Okay." He dragged a backpack over and helped her lean against it, taking the opportunity to touch her shoulder again—her shoulder was so round...
 
-　　“谢谢，”萨琳娜闭了下眼睛，“郭，你是个很可靠的人……”
+"Thank you," Salina closed her eyes. "Guo, you are a very reliable person..."
 
-　　郭逸居然脸红了，可靠这词在现在可值得玩味呀。
+Guo Yi actually blushed. The word "reliable" was worth pondering now.
 
-　　“今天要不是子良救我，我就被打死了。”郭逸赶紧发挥中华民族的传统美德，谦虚一番。
+"If Ziliang hadn't saved me today, I would have been beaten to death." Guo Yi quickly displayed the traditional virtue of the Chinese nation and was modest.
 
-　　“维尼要是不救你，我们也逃不掉。”维尼就是薛子良的英文名。萨琳娜又喘息了一下，“现在的局面很不乐观，很不乐观……”
+"If Winnie hadn't saved you, we wouldn't have escaped either." Winnie was Xue Ziliang's English name. Salina gasped for breath again. "The current situation is not optimistic, not optimistic at all..."
 
-　　正说着话，薛子良背了一具尸体回来，放在石头上，雨已经停了，萨琳娜勉强扶着棍子出来，一起检看。
+As they were talking, Xue Ziliang came back with a body on his back and placed it on a rock. The rain had stopped. Salina managed to get out with the help of a stick, and they examined it together.
 
-　　这是一具年青人的尸体，中枪死的。看到一个被自己打死的人摆在眼前，让小郭很不舒服。死亡使得人面目扭曲，不过还是能看出长相是典型的南方汉人。薛子良从背包里找出一包乳胶手套，一人发了一双。萨琳娜从腰里抽出一柄匕首，权当解剖工具。
+It was the body of a young man, shot to death. Seeing a person he had killed lying in front of him made Little Guo very uncomfortable. Death had distorted the man's face, but he could still see that he had the typical features of a southern Han Chinese. Xue Ziliang found a pack of latex gloves in his backpack and gave each of them a pair. Salina drew a dagger from her waist and used it as a dissection tool.
 
-　　死者双手满是胼胝，上肢粗壮，筋肉结实，显然长期从事劳力工作。脚上穿草鞋，脱去后发现脚底有厚厚的胼胝，系长期赤脚走路造成的。皮肤上有许多寄生虫叮咬的痕迹，有疥虫感染。萨琳娜撬开尸体的嘴，让薛子良用手电照，牙齿雪白，但是磨损严重，这是长期食用掺有杂质的粮食所致。
+The deceased's hands were covered with calluses, his upper limbs were strong, and his muscles were firm, indicating that he had been engaged in manual labor for a long time. He was wearing straw sandals. After taking them off, they found thick calluses on the soles of his feet, caused by walking barefoot for a long time. There were many signs of parasite bites on his skin, and he had a scabies infection. Salina pried open the corpse's mouth and had Xue Ziliang shine a flashlight on it. His teeth were white, but severely worn, which was caused by long-term consumption of food mixed with impurities.
 
-　　割开身上的衣服，果然没有任何内衣。衣服的质地是一种粗棉布，织得非常粗，染成一种带黑青色的蓝，薛子良捻了一会，说这大概是一种植物染料染的，染色不均匀，脱色褪色严重。无论如何都不可能是工厂里的出品。
+They cut open his clothes, and sure enough, there was no underwear. The fabric was a coarse cotton cloth, very roughly woven, and dyed a blackish-blue color. Xue Ziliang rubbed it for a while and said that it was probably dyed with a plant-based dye. The dyeing was uneven, and the color had faded severely. In any case, it couldn't have been a factory product.
 
-　　检验完毕，薛子良去把尸体丢到了河里，萨琳娜脱下手套，脸色变得愈发苍白了。
+After the examination, Xue Ziliang went to throw the body into the river. Salina took off her gloves, her face turning even paler.
 
-　　“我有点相信他们说得话了——”她说，“死者无论如何都不像是一个生活在现代社会里的人。”
+"I'm starting to believe what they said—" she said. "The deceased doesn't look like a person living in modern society at all."
 
-　　“难道是什么处于原始社会的部族？”
+"Could it be some tribe in a primitive society?"
 
-　　“要这么说的话，亚洲地区只有东南亚山区还有少量原始部族，但是地点和人种特征都不符合。”萨琳娜说，“这些部落不会纺织，更不用说染色了。能做到这二点，就不是原始部落。”
+"If you say so, there are only a few primitive tribes in the mountainous areas of Southeast Asia, but the location and racial characteristics don't match," Salina said. "These tribes can't weave, let alone dye. If they can do these two things, they are not a primitive tribe."
 
-　　“现在真是1628年？”
+"Is it really 1628 now?"
 
-　　讨论了一会，还是得不出任何结论，他们到了古代的中国这个说法谁也无法相信。唯一的办法就是继续前进，一直走到有人烟的地方，到时候自然就真相大白了。
+After a while of discussion, they still couldn't reach any conclusion. No one could believe the claim that they had arrived in ancient China. The only way was to keep moving forward until they reached a populated area, and then the truth would naturally be revealed.
 
-　　刚才的激战让他们对前面的路途安全不甚乐观。郭逸的64手枪失落以后没再找到，何况找得到他也没子弹了。两个ATF入境的时候武器又都被海关暂扣了，现在除了三柄军用匕首之外什么武器也没有。刚才的袭击幸亏对方只有棍棒，要是有铁枪或者更多的刀剑，今天就没这么便宜了。
+The recent fierce battle made them not very optimistic about the safety of the road ahead. Guo Yi's Type 64 pistol was lost and he couldn't find it, and even if he did, he had no more bullets. The weapons of the two ATF agents were temporarily detained by customs when they entered the country. Now, apart from three military daggers, they had no weapons. Fortunately, the attackers only had clubs. If they had iron spears or more swords, it wouldn't have been so easy today.
 
-　　郭逸把三根木棍都削尖了，又生了一堆火，慢慢的把尖端烤干烤硬。这是从《鄂豫皖苏区革命斗争史》上看来的，据说在粪缸里泡几天会更好。
+Guo Yi sharpened the three wooden sticks, built a fire, and slowly dried and hardened the tips. He had learned this from "The History of the Revolutionary Struggle in the E-Yu-Wan Soviet Area." It was said that it would be even better if they were soaked in a manure pit for a few days.
 
-　　薛子良照顾萨琳娜这个病号，走路放缓了不少，也让浑身疼的小郭借机喘息了一番。越往前，水声越大，这里的地势变化变得陡峭起来，乱石坡地时时可见。一行人连走带爬，转过个坡，前面是一大片的石滩，河水从九级岩石上倾泻而下，发出雷鸣般的轰声。河床上乱石累累，散布水中。江水中有一簇直径十多米的石堆，顶端开裂，状如花瓣，呈粉红色，有的如展开水面的荷花；有的如同老翁对弈；有的如渔翁垂钓，还有的因为水流冲刷，石窝中石块不住的旋转碰撞，发出咣当咣当的响声。
+Xue Ziliang took care of the patient, Salina, and slowed down his pace, which also gave the aching Little Guo a chance to catch his breath. The further they went, the louder the sound of the water became. The terrain here became steeper, and rocky slopes were often seen. The group walked and climbed, and after turning a slope, they saw a large stone beach in front of them. The river water cascaded down from nine levels of rocks, making a thunderous roar. The riverbed was littered with rocks, scattered in the water. In the river, there was a cluster of rocks more than ten meters in diameter, with cracked tops, shaped like petals, and pink in color. Some were like lotus flowers spreading on the water; some were like old men playing chess; some were like fishermen fishing, and some, due to the erosion of the water, had rocks in the potholes constantly rotating and colliding, making a clanging sound.
 
-　　【注：这些景色都是从过去描写百仞滩的文章里摘录的。在现代的百仞滩有许多历史上有名的石头已经没有了】
+[Note: These scenes are excerpts from past articles describing Bairen Tan. Many of the historically famous rocks in modern Bairen Tan are gone.]
 
-　　“景色还真不错……”经历了刚才一场生死搏斗的三人组，心情都好了许多，正走着，忽然发现前面石头滩上，正站着四个满身行李的人——正是明家一家子。
+"The scenery is really nice..." The trio, who had just experienced a life-and-death struggle, were in a much better mood. As they were walking, they suddenly found four people with a lot of luggage standing on the stone beach ahead—it was the Ming family.
 
-　　他们在路上休息耽搁的时候，原本落在后面的这家人已经反抄到前面了。见他们走近，两位妇女都露出了警觉又惊惶的神情，小郭想多半是因为看到了路上的尸体。
+While they were resting on the road, this family, who had been behind, had overtaken them. Seeing them approach, the two women showed a vigilant and frightened expression. Little Guo thought it was probably because they had seen the bodies on the road.
 
-　　脾气最大的老头子却连看也不看他们，一个人蹲在一块滩头上的大石头下，双手抱头，似乎在苦思冥想。
+The old man with the worst temper didn't even look at them. He squatted under a large rock on the beach, holding his head in his hands, as if deep in thought.
 
-　　郭逸看过去，那石头上不过是勒刻着三个巴掌大的字“百仞滩”，这有什么好研究的？
+Guo Yi looked over. The rock was only engraved with three palm-sized characters: "Bairen Tan." What was there to study?
 
-　　眼看薛子良要凑过去，那警察MM猛得后退了一步，摆出一副戒备的模样，搞得薛子良莫名其妙。
+Seeing Xue Ziliang about to approach, the policewoman MM suddenly took a step back and assumed a defensive posture, which made Xue Ziliang confused.
 
-　　老太太拉着儿媳妇的手，看着他们手里削尖的木棍子，挤出一点笑意来：
+The old lady held her daughter-in-law's hand, looked at the sharpened wooden sticks in their hands, and squeezed out a smile:
 
-　　“没啥没啥，是熟人就好……”
+"It's nothing, it's nothing, it's good that you're acquaintances..."
 
-　　小郭赶紧上去，把一路上发生的事情都如实说了一遍，说到被十多个人袭击的事情，他们明显表示出不相信的模样，直到他掏出自己的证件，这才打消了一点对方的疑虑，那个叫慕敏的漂亮警察MM把他的证件验看了半天，才还给了他。
+Little Guo hurried up and told them everything that had happened along the way. When he mentioned being attacked by more than a dozen people, they clearly showed disbelief. It wasn't until he took out his ID that their doubts were slightly dispelled. The beautiful policewoman MM named Mu Min examined his ID for a long time before returning it to him.
 
-　　“别介意，现在冒充公安的假证件太多了。”她一屁股坐在石块上，指了指身边的石头，站一旁发呆的先生赶紧坐了下来。
+"Don't mind it, there are too many fake police IDs nowadays." She sat down on a rock and pointed to the rock beside her. The gentleman standing there in a daze quickly sat down.
 
-　　靠，真听话。还没等小郭鄙视下其先生，慕敏就开始说起系统内部的一些事情了，两人都算是一个系统内的，业务部门虽然不同，还能聊得起来。一聊才知道，原来这MM很强，在治安3年，刑侦5年，政治部1年，属于能文能武实干人物。聊着聊着，郭逸发觉对方眼神中的戒备之意消失了不少，他猛得醒悟过来：这妞是在盘他的“海底”，就算你证件能搞到100％的逼真度，系统内的事情，不在系统里是绝对搞不清的。
+Damn, so obedient. Before Little Guo could despise her husband, Mu Min began to talk about some internal matters of the system. Both of them were in the same system. Although their business departments were different, they could still chat. After chatting, he found out that this MM was very strong. She had been in public security for 3 years, criminal investigation for 5 years, and the political department for 1 year. She was a capable person who could handle both civil and military affairs. As they chatted, Guo Yi found that the wariness in her eyes had disappeared a lot. He suddenly realized: this girl was checking his "background." Even if you could get a 100% realistic ID, you would never know the internal affairs of the system if you weren't in it.
 
-　　厉害！郭逸不由暗自惭愧，人和人的差距，乍就这么大呢？
+Amazing! Guo Yi couldn't help but feel ashamed. The gap between people was so big.
 
-　　双方都亮过底牌，戒备也小了不少，李梅——老太太更热情起来，看到萨琳娜身体不大好，有点发烧，从行李里给找药出来，又拿蜜饯、火腿肠饼干之类的乱七八糟的一堆东西招待，特工三人组从早晨出发之后就没吃过什么东西，又剧烈运动了一番，肚子里都饿得叽哩咕噜，薛子良一边吞着火腿肠，一边小声对郭逸说这东西防腐剂肯定超标，而且都是油和淀粉，对健康极端的有害……
+After both sides had shown their cards, their vigilance was much lower. Li Mei—the old lady became more enthusiastic. Seeing that Salina was not well and had a slight fever, she found medicine from her luggage and offered a pile of miscellaneous things like preserved fruits, ham sausages, and biscuits. The trio of agents hadn't eaten anything since they set out in the morning and had exercised vigorously. Their stomachs were growling. While swallowing a ham sausage, Xue Ziliang whispered to Guo Yi that this thing definitely had excessive preservatives, and it was all oil and starch, which was extremely harmful to health...
 
-　　“你可真够挑剔的！怕死就别吃。”郭逸极度地对这个ABC不满，倒不是因为这个混蛋一天到晚米国最伟大的模样，而是他总是抢着做搀扶萨琳娜的工作，这使得小郭的心态微妙的不平衡起来。
+"You're so picky! If you're afraid of dying, don't eat it." Guo Yi was extremely dissatisfied with this ABC, not because this bastard acted like America was the greatest all day long, but because he always rushed to help Salina, which made Little Guo's mentality subtly unbalanced.
