--- a/_posts/2009-11-5-2-01900.md
+++ b/_posts/2009-11-5-2-01900.md
@@ -1,93 +1,93 @@
 ---
 layout: post
-title: 第十九节 锻炼锻炼
+title: Section 19: Tempering
 category: 2
 path: 2009-11-5-2-01900.md
 tag: [normal]
 ---
 
-　　郭逸在医务室打了破伤风，又在脑袋上缝了几针。河马本来还想开个吊针下点抗生素预防发炎，一想现在的抗生素是有出没进，大明的细菌也不存在抗药性就吝啬的只给了点药片。郭逸出来透透气，看到已经处理好伤口的薛子良坐在医务室帐篷外的石头上，闷着头抽烟。此人刚从码头被赶回来——萨琳娜被转送到了船上的医务室去了——她的状况比较严重，薛子良也想跟去，却被拒绝了。任凭他如何在码头上又跳又吼，站岗的叶孟言就是不许他上交通艇。
+Guo Yi received a tetanus shot and a few stitches on his head at the infirmary. He Ma originally wanted to give him an IV drip with some antibiotics to prevent inflammation, but then he thought that the current antibiotics were a one-way street, and the bacteria of the Ming Dynasty had no drug resistance, so he stingily only gave him some pills. Guo Yi went out for some fresh air and saw Xue Ziliang, whose wounds had been treated, sitting on a rock outside the infirmary tent, smoking with his head down. This person had just been driven back from the pier—Salina had been transferred to the infirmary on the ship—her condition was more serious. Xue Ziliang wanted to go with her but was refused. No matter how he jumped and shouted on the pier, Ye Mengyan, who was on guard, would not let him get on the transport boat.
 
-　　“我是她的同事，我有知情的权力！我抗议！”
+"I am her colleague, I have the right to know! I protest!"
 
-　　“我还最强烈的抗议，外加深表遗憾那。”叶孟言的青春痘的都变得红彤彤了，“不许上船，这是规定。”
+"I also strongly protest, plus express deep regret." Ye Mengyan's pimples turned red. "No boarding, this is the rule."
 
-　　薛子良憋了半天，嘣出一句话来：“我要找你们领导！”
+Xue Ziliang held it in for a long time and then blurted out, "I want to see your leader!"
 
-　　“领导没空，在开会研究问题。”叶孟言念念有词，“您还是回医务室呆着，我奉劝你不要在错误的道路上越走越远。”
+"The leader is busy, in a meeting to study problems." Ye Mengyan muttered, "You should go back to the infirmary. I advise you not to go further and further down the wrong path."
 
-　　薛子良看姿势满身都是漏洞，据枪都不像样的“小兵”，我一出手三秒之内就叫你趴下！他愤愤的想。不过他虽然有点狂妄，倒还不傻，知道在闹起来这里不会有人来照顾“美国友人”。眼见交通艇越跑越远，自己暂时又无处可去，只好又回到医务室这边，蹲墙角等郭逸出来——眼下他也就剩下这么个熟人了。
+Xue Ziliang looked at the "little soldier" whose posture was full of flaws and who couldn't even hold a gun properly. *I could take you down in three seconds!* he thought angrily. But although he was a bit arrogant, he was not stupid. He knew that if he made a scene, no one here would take care of the "American friend." Seeing the transport boat getting farther and farther away, and having nowhere to go for the time being, he had to go back to the infirmary and squat in a corner to wait for Guo Yi to come out—he was the only acquaintance he had left now.
 
-　　“郭，你说我们该怎么办？”ABC一脸无奈，“没想到我会当亚瑟王朝的美国人！”
+"Guo, what do you think we should do?" the ABC said with a helpless look on his face. "I never thought I would be a Connecticut Yankee in King Arthur's Court!"
 
-　　【注：马克吐温的作品，美国人回到了中世纪的英国，用铁丝网、机关枪和毒气战胜了中古世纪的英国武士。可能是现代穿越小说的鼻祖】
+[Note: A work by Mark Twain, in which an American travels back to medieval England and defeats the medieval English knights with barbed wire, machine guns, and poison gas. It may be the originator of modern transmigration novels.]
 
-　　“你就节哀顺变吧。”郭逸虽然自己也没从这巨大的变故里回过神来，但看到薛唯尼一脸沮丧的样子，还是有点恶意的快乐。忽然又觉得这话不妥当，有咒萨琳娜完蛋的意思——怎么说萨琳娜也是和薛的关系更近一些。
+"Just accept your fate." Although Guo Yi himself had not recovered from this huge change, he still felt a little malicious pleasure seeing Xue Weini's dejected look. Suddenly, he felt that this was inappropriate, as it seemed to be cursing Salina to her doom—after all, Salina was closer to Xue.
 
-　　至于自己，在被缝合针穿透他的皮肉的时候，他的灵魂就在考虑未来该怎么办。身为一个合格的公务员，小郭当然知道在任何时候都要积极靠拢组织个人才会有发展。
+As for himself, when the suture needle pierced his flesh, his soul was considering what to do in the future. As a qualified civil servant, Little Guo certainly knew that he had to actively get close to the organization at all times to have personal development.
 
-　　说起来穿越公司的头头脑脑们，小郭都给他们做过材料，总BOSS是[文德嗣][y002]，一个是企业里的工程师[王洛宾][y003]，还有什么[萧子山][y001]——一个失业的销售经理……
+Speaking of the leaders of the Transmigration Company, Little Guo had prepared materials for all of them. The big BOSS was [Wen Desi][y002], one was an engineer in an enterprise, [Wang Luobin][y003], and there was also [Xiao Zishan][y001]—an unemployed sales manager...
 
-　　这些人，过去小郭一个电话要他们来喝茶，说8点不敢8：01到。如今用屁股想也知道自己别说打电话，就是去上门求见也没戏——人如今肯定都是政治局常委一级的人物，真TMD沐猴而冠。
+In the past, Little Guo could summon these people for a "cup of tea" with a single phone call, and if he said 8 o'clock, they wouldn't dare to arrive at 8:01. Now, he knew without even thinking that he couldn't even get a meeting with them, let alone call them—they were definitely at the level of the Politburo Standing Committee now. What a bunch of monkeys in crowns.
 
-　　郭逸考虑了半天，决定先去找冉耀。好歹是认识的熟人。而且他是“治安组长”，显然属于领导。自己也是警察系统出身，去那里肯定能专业对口。他不知道怎么去找，就在营地里到处乱撞，果然没费事就找到了——刚问了几个人就因为没有袖标被警惕性很高的群众扭送到治安组，直接送冉耀那里去了。
+Guo Yi thought for a long time and decided to go to Ran Yao first. At least he was an acquaintance. And he was the "security team leader," obviously a leader. He himself was from the police system, so he would definitely be a professional match there. He didn't know how to find him, so he just wandered around the camp. Sure enough, he found him without much trouble—after asking a few people, he was taken to the security team by the highly vigilant masses because he didn't have an armband, and was sent directly to Ran Yao.
 
-　　治安组的办公室设在新的搭的帐篷里，这类公务用帐篷都紧挨着配电所，围绕着巡检司门外的配电房，无意中形成了一个行政区。治安组的帐篷在最外面，门口坐着个袖子上别着“治安”袖章的人，腰里一边挂着一只五四式的仿牛皮混凝纸枪套，一边是警棍，脚边还有顶80盔和防暴盾牌。
+The security team's office was in a newly erected tent. These official tents were all next to the power distribution station, surrounding the power distribution room outside the inspection department gate, inadvertently forming an administrative area. The security team's tent was on the outermost side. At the entrance sat a person with a "security" armband on his sleeve. He had a Type 54-style imitation cowhide concrete paper holster on one side of his waist and a baton on the other. At his feet were a Type 80 helmet and a riot shield.
 
-　　冉耀正在一张办公桌后面写着什么，看到郭逸进来没有露出意外的神色。
+Ran Yao was writing something behind a desk. He didn't look surprised when he saw Guo Yi come in.
 
-　　“坐吧。”
+"Have a seat."
 
-　　郭逸打量了下这个不大的帐篷，里面除了几台电脑就是正在充电的对讲机，几个标注着英文的子弹包装木箱叠在一旁。
+Guo Yi looked around the small tent. Inside, besides a few computers, there were walkie-talkies being charged, and a few wooden boxes of ammunition marked in English were stacked on the side.
 
-　　“你怎么自己来了？”冉耀从桌上拿了张卡纸给他，“本来要派人给你送身份证的。没证件在营地里很麻烦，连吃饭都没地方。”
+"Why did you come by yourself?" Ran Yao took a card from the table and gave it to him. "I was going to send someone to deliver your ID card. It's very troublesome to be in the camp without an ID. You can't even eat."
 
-　　“嗯，谢谢。”手上的张卡纸就是普通的做员工挂牌的样子，上面有贴他的照片，除了姓名之类的个人资料，还有一个打印上去的条码，他的号码是：临0001号。
+"Um, thank you." The card in his hand was just like a normal employee ID badge. It had his photo on it, and besides personal information like his name, there was also a printed barcode. His number was: Lin 0001.
 
-　　还0001号……郭逸一脸苦笑，他想这“临”大约是“临时”的意思。显然，他还没被这个几小时前还被他称为“匪徒”的团体完全接纳，虽然这在意料之中，心里还是蛮失落的。一时间也不知道该如何开口——他的脸皮还没锻炼得足够厚。
+Number 0001... Guo Yi had a wry smile on his face. He thought that "Lin" probably meant "temporary." Obviously, he had not been fully accepted by this group that he had called "bandits" just a few hours ago. Although this was expected, he still felt quite disappointed. For a moment, he didn't know how to start—his skin hadn't been thickened enough yet.
 
-　　“既然这里是另一个时空，我们又回不去了……我还是希望为组织工作，做一些力所能及的事情……”郭逸吞吞吐吐地说着。
+"Since this is another time and space, and we can't go back... I still hope to work for the organization and do what I can..." Guo Yi said hesitantly.
 
-　　“想加入治安组？”冉耀点点头。
+"Want to join the security team?" Ran Yao nodded.
 
-　　“是的，我觉得这方面我的专业还是对口的。”郭逸说话流畅起来，接着他介绍了自己的学历和工作经历，越说他越有信心，冉耀多半是刑侦方面出身，专门的国家安全工作人员，他可是独一份，21世纪最需要的是人才，17世纪不是更需要人才……
+"Yes, I think my major is a good fit for this." Guo Yi's speech became fluent. He then introduced his education and work experience. The more he spoke, the more confident he became. Ran Yao was probably from a criminal investigation background. As a dedicated national security officer, he was unique. The 21st century needed talent the most, and didn't the 17th century need talent even more...
 
-　　“是这样的，”冉耀用一种赞赏的口气，“你这样的人选，我们治安组是欢迎之至。不过，你们的事情，不是我能做主的。”
+"That's right," Ran Yao said in an appreciative tone. "A candidate like you is most welcome in our security team. However, I can't make the decision on your matter."
 
-　　“这个我明白，”郭逸的话里流露出一丝苦涩，“治安组这样的部门，肯定要经过考验才行。”他忽地站了起来，敬了一个礼，大声说：“我愿意接受组织上的任何考察！”
+"I understand that," a trace of bitterness appeared in Guo Yi's words. "A department like the security team definitely needs to be tested." He suddenly stood up, saluted, and said loudly, "I am willing to accept any investigation from the organization!"
 
-　　冉耀被他的举动吓了一跳，想这人是不是受了什么刺激：“坐、坐，小郭同志，不要激动。”
+Ran Yao was startled by his action, thinking that this person might have been stimulated in some way. "Sit, sit, Comrade Little Guo, don't get excited."
 
-　　郭逸的脸有点发烧。赶紧坐了下来：“对不起，我只是……”
+Guo Yi's face was a little hot. He quickly sat down. "I'm sorry, I just..."
 
-　　“没关系没关系，”冉耀拿出一张纸，“根据内务民政委员会的派令，你现在属于人力资源组调派，注意每天早晨都会有派工单告诉你的任务是什么。现在凭这张纸到计委办公室去领你的东西吧。”
+"It's okay, it's okay," Ran Yao took out a piece of paper. "According to the order of the Internal Affairs and Civil Affairs Committee, you are now assigned to the human resources team. Pay attention to the work order every morning that will tell you what your task is. Now, take this paper to the Planning Committee office to get your things."
 
-　　他站起来，一脸诚恳的笑容，拍了下小郭的肩膀：“小郭同志，其实我是很希望你马上到这里来工作的，但是制度就是制度，在你的关系没有转正之前，先在其他岗位上锻炼锻炼——都是为革命服务嘛。”
+He stood up, with a sincere smile on his face, and patted Little Guo on the shoulder. "Comrade Little Guo, I actually hope you can come to work here right away, but the system is the system. Before your status is regularized, you should first temper yourself in other positions—it's all for the revolution."
 
-　　在通向百仞滩的4号测绘点的土路上，有一辆北京212奔驰着。车里坐的是总体负责技术方面的执委[王洛宾][y003]和工程建筑组的梅晚、[李潇侣][y156]。
+On the dirt road to survey point No. 4 of Bairen Tan, a Beijing 212 was speeding along. In the car were [Wang Luobin][y003], the executive committee member in charge of technology, and Mei Wan and [Li Xiaolü][y156] from the engineering and construction team.
 
-　　汽车在坑坑洼洼的土路上开着，这里还根本算不上路，只是工程组为了博铺－百仞滩公路勘测而临时标记出来的一些适宜越野车行驶的路段。
+The car was driving on a bumpy dirt road. This could hardly be called a road, but rather some sections of road suitable for off-road vehicles that the engineering team had temporarily marked out for the Bopu-Bairen Tan highway survey.
 
-　　今天早晨开始公路勘测以来，[王洛宾][y003]已经在这几个测绘点之间跑了几次，有时候坐车有时候步行。在规划中，百仞滩将是穿越者的主要生产、生活基地，此地对穿越者来说十分有利：这里地处文澜江这条临高第一大河旁，工业、生活上的给排水方便；现代又是百仞滩水电站的所在地，20世纪能够修水电站，17世纪也可以。基地建在水电站旁有利于就近用电，免除了架设线路的大量资材消耗和建成后的保护成本；百仞滩离博铺港8公里，离临高县城4公里。彼此之间可以互相呼应。三个基地沿文澜河一字排开，有利于控制两岸农业区。
+Since the highway survey began this morning, [Wang Luobin][y003] had run between these survey points several times, sometimes by car and sometimes on foot. In the plan, Bairen Tan would be the main production and living base for the transmigrators. This place was very favorable for the transmigrators: it was located next to the Wenlan River, the largest river in Lingao, which was convenient for industrial and domestic water supply and drainage; it was also the site of the Bairen Tan hydropower station in modern times. If a hydropower station could be built in the 20th century, it could also be built in the 17th century. Building the base next to the hydropower station would be beneficial for using electricity nearby, saving a lot of materials for laying lines and the protection costs after completion; Bairen Tan was 8 kilometers from Bopu Port and 4 kilometers from Lingao County. They could support each other. The three bases were arranged in a line along the Wenlan River, which was conducive to controlling the agricultural areas on both sides of the river.
 
-　　要在百仞滩展开基地，就得把大量的设备物资运到工地，博铺－百仞滩简易公路就这样列入了最优先工程项目。
+To develop the base at Bairen Tan, a large amount of equipment and materials had to be transported to the construction site. The Bopu-Bairen Tan simple highway was thus listed as the highest priority project.
 
-　　车颠簸的很厉害，[王洛宾][y003]望着窗外的风景，听着风声呼呼，颇有感触。他今天在线路上跑了一天，其实他并不懂测绘或者筑路方面的专业知识，但是这个工程的难度心里还是有数的。建筑工程组集中了穿越者中所有的勘测、规划、建筑工程方面的技术人员，每个人都是各有专长，在大分工的社会体系里游刃有余，到了这样一个需要全才的地方就不太行了。今天的勘测方面和公路设计的讨论已经暴露出很多问题，但是穿越者需要这条公路，身为工业、通讯、能源、交通委员会的正职委员，一定要协调好自己的指挥下的第一项工程，顺便锻炼好这支队伍，执委会需要建设人才啊。他越想心情越振奋，不时把想到的问题随手记在小本子上。
+The car was very bumpy. [Wang Luobin][y003] looked at the scenery outside the window, listening to the whistling wind, and felt quite emotional. He had been running on the line all day today. In fact, he didn't know much about surveying or road construction, but he had a good idea of the difficulty of this project. The construction engineering team had gathered all the technical personnel in surveying, planning, and construction engineering among the transmigrators. Everyone had their own expertise and was at ease in a society with a high degree of division of labor, but it was not so good in a place that required all-rounders. Today's discussion on surveying and highway design had already exposed many problems, but the transmigrators needed this highway. As the head of the Industry, Communications, Energy, and Transportation Committee, he had to coordinate the first project under his command, and at the same time, train this team. The Executive Committee needed construction talent. The more he thought about it, the more excited he became, and he jotted down the problems he thought of in a small notebook from time to time.
 
-　　[王洛宾][y003]转脸瞅瞅[李潇侣][y156]，她翻起了衣服的领子，缩着头，似乎在打瞌睡。他微微一笑，觉得这个女人有点萎靡不振。在工作的时候她很少说话，干活的质量却很高。
+[Wang Luobin][y003] turned to look at [Li Xiaolü][y156]. She had turned up her collar and was shrinking her head, as if she was dozing off. He smiled slightly, feeling that this woman was a little listless. She rarely spoke at work, but the quality of her work was very high.
 
-　　少时，汽车猛地一颠，[李潇侣][y156]醒了。
+After a while, the car suddenly bumped, and [Li Xiaolü][y156] woke up.
 
-　　开车的梅晚减慢些车速，车子稳当了些。[王洛宾][y003]问：“李工，你初步勘测下来觉得这条公路该怎么修？”
+Mei Wan, who was driving, slowed down the car, and the car became more stable. [Wang Luobin][y003] asked, "Engineer Li, what do you think of this highway after your preliminary survey?"
 
-　　[李潇侣][y156]说：“整条路难度不大，有坡度，但是坡度小，地面相对平缓。主要问题是我们手里的地图都是现代的，实地勘测下来差距不小，没法做图上选线的工作。”
+[Li Xiaolü][y156] said, "The whole road is not very difficult. There are slopes, but the slopes are small, and the ground is relatively flat. The main problem is that the maps we have are all modern. The field survey shows a big difference, so we can't do the route selection on the map."
 
-　　梅晚插嘴说：“现在等于是先改地图，再标线路。”
+Mei Wan interjected, "Now it's like changing the map first, and then marking the route."
 
-　　“就是这样。”[李潇侣][y156]说，“地图准确的话，我晚上花几个小时图上选线，白天带人现地选线标线好能开始动工了。”
+"That's right," [Li Xiaolü][y156] said. "If the map is accurate, I can spend a few hours at night selecting the route on the map, and then lead people to select and mark the route on the ground during the day, and we can start construction."
 
-　　现在测绘队在她的带领下只测绘了3公里，一个专业的测绘队，至少要配备7个人，执委会倒是给她配了12个人，但是多数人都不懂测绘，她只好从头开始教，怎么定线，怎么拿坡杆，水平仪如何看，测绘队成了教学队，一上午都没走完500米，下午大家都熟悉了，进度才有所加快。
-[y001]: /characters/y001 "萧子山"
-[y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
-[y156]: /characters/y156 "李潇侣"
+Now the survey team, under her leadership, had only surveyed 3 kilometers. A professional survey team should have at least 7 people. The Executive Committee had assigned her 12 people, but most of them didn't know how to survey, so she had to teach them from scratch, how to set the line, how to hold the slope pole, how to read the level. The survey team became a teaching team. They didn't even finish 500 meters in the morning. In the afternoon, everyone became familiar with it, and the progress accelerated.
+[y001]: /characters/y001 "Xiao Zishan"
+[y002]: /characters/y002 "Wen Desi"
+[y003]: /characters/y003 "Wang Luobin"
+[y156]: /characters/y156 "Li Xiaolü"
