--- a/_posts/2009-11-6-2-02000.md
+++ b/_posts/2009-11-6-2-02000.md
@@ -1,76 +1,76 @@
 ---
 layout: post
-title: 第二十节 筑路（一）
+title: Section 20: Road Construction (Part 1)
 category: 2
 path: 2009-11-6-2-02000.md
 tag: [normal]
 ---
 
-　　“王委员，看起来修路不会太平。”梅晚意味深长的说。
+"Committee Member Wang, it seems that road construction will not be peaceful," Mei Wan said meaningfully.
 
-　　“怎么？”
+"How so?"
 
-　　“听说早晨到临高去的侦察队在百仞滩被袭击了。”梅晚一边说一边盘，躲开了路上的一块大石头。普通群众对中美三人组的事情并不很清楚，以为他们也是派出去的侦察队。
+"I heard that the reconnaissance team that went to Lingao this morning was attacked at Bairen Tan." Mei Wan said while turning the steering wheel to avoid a large rock on the road. The common people were not very clear about the matter of the Chinese-American trio, thinking that they were also a reconnaissance team sent out.
 
-　　“有这回事，你怎么知道的？这事还没上内部简报。”郭逸回来后报告的情况，还处于保密阶段。
+"There is such a thing, how do you know? This matter has not yet been on the internal briefing." The situation reported by Guo Yi after his return was still in a confidential stage.
 
-　　“尸体都漂到河滩上了，不是瞎子都看得见，这有啥秘好保得？”梅晚说，“新环境新气象，有些脑残的习惯就不要再延续下去了吧。”
+"The bodies have all floated to the river beach. Anyone who is not blind can see it. What's the secret to keep?" Mei Wan said, "New environment, new atmosphere. Some brain-dead habits should not be continued."
 
-　　“怕什么，十几个人围攻三个，一样被打退，三个受轻伤，对方可死了好几个。”[王洛宾][y003]故作轻松。
+"What's there to be afraid of? More than a dozen people besieged three, and they were still beaten back. The three suffered minor injuries, but several of the other side died," [Wang Luobin][y003] said, pretending to be relaxed.
 
-　　“不能这么说，要来几枝冷箭也让人提心吊胆的。大伙在工地上又不能穿着防刺服装干活——太热了。”
+"You can't say that. A few stray arrows would also make people nervous. And everyone on the construction site can't work in anti-stab clothing—it's too hot."
 
-　　他一路边开车边反映了公路建设中的问题：会开推土机的人太少，那么多大型机械只能运作其中的二三台；没有安全帽，虽然人手一个80钢盔，但戴这个上工实在太累了。建议赶快做一批柳条帽——他们在河边发现了一些柳树林；饮用水，现在每天补充饮用水都得回到海滩上去；身体矿物质流逝很多，需要盐来补充，计委又不肯直接拨发盐给他们，说只有伙食办才能领，好说歹说半天才松口说这事得医疗卫生组打证明才行……
+As he drove, he reported the problems in the highway construction: there were too few people who could drive bulldozers, so only two or three of the many large machines could be operated; there were no safety helmets, and although everyone had a Type 80 steel helmet, it was too tiring to wear it to work. He suggested making a batch of wicker hats as soon as possible—they had found some willow groves by the river; drinking water, now they had to go back to the beach every day to replenish drinking water; the body lost a lot of minerals and needed salt to supplement it, but the Planning Committee was unwilling to directly allocate salt to them, saying that only the food office could get it. After much persuasion, they finally relented and said that this matter had to be certified by the medical and health group...
 
-　　“还有，现在我们建设工程组的正式编制人员就那么几个，都是技术人员。建筑工人全是从基本劳力组里调派来的生手。没技术不要紧，我们教得了——农民工不也一样能干？可问题是第二天就给我们换一批人——还美日其名平均工作量。拜托这又不是吃大锅饭，能这么搞平均主义吗？得，前一批还没教会，又来一批新的，这不瞎折腾吗？你看今天工地上一口气来了三百多人，干了多少活？”
+"Also, now our construction engineering team has only a few official members, all of whom are technical personnel. The construction workers are all unskilled laborers transferred from the basic labor group. It doesn't matter if they don't have skills, we can teach them—can't migrant workers do the same? But the problem is that they change a batch of people for us the next day—and they call it averaging the workload. Please, this is not eating from the big pot, can we do egalitarianism like this? Well, the previous batch has not been taught yet, and a new batch has come. Isn't this just messing around? Look, more than 300 people came to the construction site today, how much work did they do?"
 
-　　“是这样。”[王洛宾][y003]若有所思，今天派到筑路工地上的劳动力小组的确多数都没活干。
+"That's right," [Wang Luobin][y003] said thoughtfully. Indeed, most of the labor groups sent to the road construction site today had no work to do.
 
-　　“得组建个专门的工程队搞基建施工，人员要固定。”梅晚说，“我要求也不高，50个人好了，力活可以派基本劳动力来干。”
+"We need to form a dedicated engineering team for infrastructure construction, and the personnel must be fixed," Mei Wan said. "My request is not high, 50 people will be fine. The heavy work can be done by the basic labor force."
 
-　　两个人一路说着公路的事情，来到了临时的公路建设指挥部，为了就近组织施工，这个地方离开营地差不多有2公里，条件很简陋，也没有拉电。只是一个帐篷而已。
+The two of them talked about the highway all the way and came to the temporary highway construction headquarters. In order to organize the construction nearby, this place was almost 2 kilometers away from the camp. The conditions were very simple, and there was no electricity. It was just a tent.
 
-　　走到里面，晒了一天太阳的帐篷里还是又热又燥，各种图板、测绘器材塞得到处都是。一张大桌子上堆着成卷的勘测图纸。
+Walking inside, the tent, which had been exposed to the sun all day, was still hot and dry. Various drawing boards and surveying equipment were stuffed everywhere. A large table was piled with rolls of survey drawings.
 
-　　梅晚拿出了规划方案，路线选在在文澜河的东岸。河东岸较于西岸有更大的发展空间，未来还可和红牌、马袅等港口连成一片，形成产业基地－港口运输一体化。现代的临高的几个主要工业开发区也设置文澜河的西岸。
+Mei Wan took out the planning proposal. The route was chosen on the east bank of the Wenlan River. The east bank of the river has greater development potential than the west bank. In the future, it can be connected with ports such as Hongpai and Maniao to form an integrated industrial base and port transportation. Several major industrial development zones in modern Lingao are also located on the west bank of the Wenlan River.
 
-　　对于来到17世纪的穿越者来说，完善的道路体系是重新构建现代社会的基础。现代化的道路不仅有利于物资和人员流通，更大大增加了政权对社会的控制力。中国虽然是最早建立起全国性道路交通网的国家之一，但是在道路延伸的范围和深度依然是很不够。以海南为例，明代仅有官方的环岛驿路一条，各县内均无较完善的大路，只有一些人踩牛踏出来的小路。无论官道还是一般的大路小路，几乎都没有路面硬化和排水设施，所谓“无雨三尺土，有雨一身泥”，在明代的海南同样适用。
+For the transmigrators who came to the 17th century, a complete road system was the foundation for rebuilding a modern society. Modern roads not only facilitate the flow of materials and personnel, but also greatly increase the regime's control over society. Although China was one of the first countries to establish a national road transportation network, the scope and depth of road extension were still very insufficient. Taking Hainan as an example, in the Ming Dynasty, there was only one official post road around the island. There were no relatively complete main roads in the counties, only some small paths trodden by people and cattle. Whether it was an official road or a general main road or small path, almost none of them had hardened road surfaces and drainage facilities. The so-called "three feet of dust without rain, a body of mud with rain" was also applicable in Hainan in the Ming Dynasty.
 
-　　相形而下，同一个时代的欧洲也高明不到哪里去。1600年以前的道路状态依然非常恶劣，古罗马时代流传下来的筑路技术已经失传，路面的坑洞是用柴捆来填塞的，甚至用这种强度很小，容易腐烂的材料做为新建道路的路基。现代筑路的思想来自意大利人托格莱塔（约1587），他在一篇文章里第一次提到了一些现代道路的基本概念，如道路必需在地下水的水平面之上，道路两侧需要有排水设施，用砾石修筑较为坚固的路基，在上面铺设碎石、砂浆的混合路面——他还指出，这种路面需要长期的维护，但是在成本上比传统的罗马式硬质石头公路要便宜的多。从17世纪开始，欧洲的筑路技术和路政才进入一个快速的发展的阶段。
+In contrast, Europe in the same era was not much better. The state of the roads before 1600 was still very poor. The road construction technology handed down from the ancient Roman era had been lost. The potholes on the road surface were filled with bundles of firewood, and even this material with very low strength and easy to rot was used as the roadbed for new roads. The idea of modern road construction came from the Italian Toglietta (around 1587). In an article, he first mentioned some basic concepts of modern roads, such as the road must be above the groundwater level, there must be drainage facilities on both sides of the road, a relatively solid roadbed should be built with gravel, and a mixed road surface of crushed stone and mortar should be laid on it—he also pointed out that this kind of road surface requires long-term maintenance, but it is much cheaper than the traditional Roman-style hard stone highway. From the 17th century, European road construction technology and road administration entered a stage of rapid development.
 
-　　穿越者的道路规划自然是雄心勃勃，这条规划中的公路，直线距离为8公里，路线总长12－16公里，按等级军路的乙级标准进行建设，这种等级军路的通过量小于每昼夜200辆，设计汽车通过最大时速为40公里/小时，整个路基宽度为7米，车行道宽度6米，双车道。
+The transmigrators' road plan was naturally ambitious. The planned highway had a straight-line distance of 8 kilometers and a total route length of 12-16 kilometers. It was to be built according to the Class B standard for military roads. This class of military road has a traffic volume of less than 200 vehicles per day and night, with a designed maximum vehicle speed of 40 km/h. The entire roadbed width is 7 meters, the carriageway width is 6 meters, and it is a two-lane road.
 
-　　“我有个看法，”[王洛宾][y003]说，“可能说得不对。你们现在对勘测方面是不是投入了太多的精力？你们是不是打算一劳永逸，一次修成永久性的公路。现在有这个必要吗？先修一条便道通上去以后再慢慢改就是了。执委会的想法是要尽快修通到百仞滩的道路，这么搞下去别说D+5，修一个月都完不了工吧？”
+"I have an opinion," [Wang Luobin][y003] said, "It may not be right. Are you putting too much effort into surveying now? Are you planning to build a permanent highway once and for all? Is it necessary now? It's fine to build a temporary road first and then slowly improve it later. The Executive Committee's idea is to open the road to Bairen Tan as soon as possible. If you go on like this, let alone D+5, you won't be able to finish it in a month, right?"
 
-　　梅晚看了下周围的几个人，大家都默不作声。冰风计算过大体的工程量，知道[王洛宾][y003]这话说得没错，但是这里只有梅晚和卓天敏稍微懂一些路桥工程，梅晚作为建筑组的组长对自己的方案又兴致勃勃，大家都不好意思去提这个工期的问题。
+Mei Wan looked at the few people around him, and everyone was silent. Bing Feng had calculated the general amount of work and knew that [Wang Luobin][y003] was right, but here only Mei Wan and Zhuo Tianmin knew a little about road and bridge engineering. As the leader of the construction team, Mei Wan was very enthusiastic about his own plan, so everyone was embarrassed to mention the issue of the construction period.
 
-　　梅晚看到自己的方案有被否定的可能，急着解释说：“这种路对我们来说已经有点奢侈了，不过未雨绸缪，先把基础打好，也好为以后的扩建改建打好基础。”
+Seeing that his plan might be rejected, Mei Wan hurriedly explained, "This kind of road is already a bit of a luxury for us, but it's better to be prepared. We'll lay a good foundation first, which will also be good for future expansion and reconstruction."
 
-　　“现在穿越伊始，我们百废待兴。什么该从简，什么该精细，虽然没有客观实际的标准，但是你们作为实际工程负责人员不是样样都必须从专业角度出发非要尽善尽美。那显然是不可能的，不管是技术还是材料现在都不是很完备。盲目追求完美有点缘木求鱼意思了。”[王洛宾][y003]说。
+"Now that the transmigration has just begun, we have a hundred things to do. What should be simplified and what should be refined, although there is no objective and practical standard, as the actual project leaders, you don't have to be perfect from a professional point of view in everything. That is obviously impossible. Neither the technology nor the materials are very complete now. Blindly pursuing perfection is a bit like trying to get fish from a tree," [Wang Luobin][y003] said.
 
-　　一直在建筑组内保持沉默的卓天敏忽然说：“我赞同王委员的看法。修路说复杂很复杂，要考虑路的坡度、考虑地质结构、考虑施工量、是否需要架桥、是否需要隧道、根据考察的情况设计施工方案……但要说简单也可以很简单，特别现在只是临时修一条便道，只要确定路的起止地点，中途必须到达的地点，然后根据经过的地形选择一条路线修筑简易土路就可以。根据实地的查勘，本地的地形不复杂，在这种地方修便道甚至不需要严格的测绘都不会有大问题。”
+Zhuo Tianmin, who had been silent in the construction team, suddenly said, "I agree with Committee Member Wang's opinion. Road construction is very complicated if you want to make it complicated. You have to consider the slope of the road, the geological structure, the amount of construction, whether you need to build bridges, whether you need tunnels, and design the construction plan based on the investigation... But it can also be very simple, especially now that we are just building a temporary road. As long as we determine the start and end points of the road, the points that must be reached in the middle, and then choose a route to build a simple dirt road according to the terrain. According to the field survey, the local terrain is not complicated. Building a temporary road in this kind of place doesn't even require strict surveying and there won't be any major problems."
 
-　　卓天敏的发言让梅晚的脸一下变得很难看，这个机电一体化本科毕业，拥有注册咨询师、建造师资格的男人虽然因为报名参加比较晚，加上还得照顾儿子，在组里一直保持低调的姿态，但是他的专业能力是有目共睹的。这让梅晚一直有些忌讳。
+Zhuo Tianmin's speech made Mei Wan's face turn ugly at once. This man, who had a bachelor's degree in mechatronics and was a registered consulting engineer and constructor, had always kept a low profile in the group because he had signed up late and had to take care of his son, but his professional ability was obvious to all. This had always made Mei Wan a little wary.
 
-　　他本来是想通过这个工程漂亮的露一手给执委会看看，同时也在群众中竖立起知名度——通过修筑高质量的公共建筑赢得人民的好感，这是很容易成功的手法。
+He had originally wanted to show off his skills to the Executive Committee through this project, and at the same time build up his reputation among the masses—it was a very easy way to win the favor of the people by building high-quality public buildings.
 
-　　但现在，他的设想显然不被[王洛宾][y003]看好，又被卓天敏当场反驳，倒落了个“没有大局观”的评价。
+But now, his idea was obviously not favored by [Wang Luobin][y003], and was refuted by Zhuo Tianmin on the spot, and he was even given the evaluation of "lacking a sense of the big picture."
 
-　　“海滩上现在有好几百人，还有那么多的物资机械，这些东西都要尽快到百仞滩！我们现在的任务是能到，不是怎么到，别本末倒置了。”他站起身来，“你提出的要求，今天晚上全部给你答复，但是方案要重新做，到D+6，车队必需到百仞滩！”
+"There are hundreds of people on the beach now, and so much material and machinery. These things must get to Bairen Tan as soon as possible! Our current task is to be able to get there, not how to get there. Don't put the cart before the horse." He stood up. "I will give you a reply to all your requests tonight, but the plan must be redone. By D+6, the convoy must reach Bairen Tan!"
 
-　　会后，如同霜打茄子一般的梅晚按[王洛宾][y003]的要求，重新组织修订了规划。新的公路属于土路面的简易公路。这样的路面只适合通过车辆较少，同时在雨天可以停止通车的条件下。考虑到这条公路上通过的车辆不会很多，此时又是农历中秋过后，临高的雨季已经结束，雨水对行车不会有很大的影响。
+After the meeting, Mei Wan, like a frost-bitten eggplant, reorganized and revised the plan according to [Wang Luobin][y003]'s request. The new highway was a simple dirt road. This kind of road surface was only suitable for a small number of vehicles and could be closed on rainy days. Considering that not many vehicles would pass on this highway, and it was after the Mid-Autumn Festival in the lunar calendar, the rainy season in Lingao had ended, so the rain would not have a great impact on driving.
 
-　　第二天，筑路工程终于进入正轨，秉承着“边勘探边设计边施工”的指导原则，一支临时组建起来的筑路工程队取代了原来闹哄哄出工不出力的基本劳力小组。
+The next day, the road construction project finally got on the right track. Adhering to the guiding principle of "surveying, designing, and constructing at the same time," a temporarily formed road construction team replaced the original noisy and unproductive basic labor group.
 
-　　因为他们没有17世纪的文澜河水文资料，不知道其历史最高水位是多少。因此在划定路线时，距离河岸的标准是按20世纪的百年一遇洪水标准再加多10％的余量。
+Because they did not have the hydrological data of the Wenlan River in the 17th century, they did not know its historical highest water level. Therefore, when defining the route, the standard for the distance from the river bank was based on the 100-year flood standard of the 20th century plus an additional 10% margin.
 
-　　路基采用的填土式，这种路基适用于平原和丘陵地区的低平地段。为了减少运输环节，决定尽量采用路边沟取土，取土坑只作为补充。
+The roadbed was of the filled-earth type, which was suitable for low-lying sections in plains and hilly areas. In order to reduce the transportation link, it was decided to use the soil from the roadside ditches as much as possible, and the borrow pits were only used as a supplement.
 
-　　施工对首先根据车辆宽度算出的公路边沟的宽度，从路基边椿向外按该宽度量出边沟的边线位置，一般都是用石灰洒线标记或者用打椿拉绳来订出边线的，梅晚不舍得用石灰，就改洒草木灰来定边。
+The construction team first calculated the width of the roadside ditch based on the width of the vehicle, and then measured the sideline position of the ditch outward from the roadbed side pile according to this width. Generally, lime was used to mark the line or stakes were driven and ropes were pulled to determine the sideline. Mei Wan was reluctant to use lime, so he used plant ash to mark the line instead.
 
-　　从边沟里挖出来的土，浅表层是水稻土或者其他富含腐殖质的土壤，这样的土施工队是不要的，修筑路基最好是采用粘土和砂性土，这二种土在工地沿线都不缺少，使用起来很方便。因为位置沿河，砂性土很多，土中夹杂有许多鹅卵石和贝壳，直接填埋进路基对路基的整体强度不利。被安排负责取土工作的卓天敏就在取土现场设置了建筑用的沙石筛，将土中的石头、贝壳都筛选出来。鹅卵石可以作为建筑材料，贝壳，梅晚则打算用它来烧石灰——不过他只知道贝壳可以烧，并不知道怎么去烧。
+The soil dug out from the roadside ditch, the shallow surface layer was paddy soil or other soil rich in humus. The construction team did not want this kind of soil. It was best to use clay and sandy soil to build the roadbed. These two kinds of soil were not lacking along the construction site and were very convenient to use. Because the location was along the river, there was a lot of sandy soil, and the soil was mixed with many pebbles and shells. Directly filling them into the roadbed was not good for the overall strength of the roadbed. Zhuo Tianmin, who was arranged to be in charge of soil borrowing, set up a sand and stone screen for construction at the soil borrowing site to screen out the stones and shells in the soil. The pebbles could be used as building materials, and Mei Wan planned to use the shells to burn lime—but he only knew that shells could be burned, and did not know how to burn them.
 
-　　被筛选过的泥土被用来填埋路基。整个路基的截面呈阶梯型，用粘土和砂性土交替分层铺设的，泥土每填高20公分就用压路机碾实二遍。这样持续把路基填土到1米。再把两边取过土的边沟整平以利于排水，整个路基就大致完成了。
+The screened soil was used to fill the roadbed. The cross-section of the entire roadbed was stepped, and it was laid in alternating layers of clay and sandy soil. The soil was compacted twice with a road roller for every 20 cm of filling. This continued until the roadbed was filled to 1 meter. Then the roadside ditches on both sides where the soil had been taken were leveled to facilitate drainage, and the entire roadbed was roughly completed.
 
-　　相形之下，路面的工作要复杂一些。土质的路面要求平坦密实，天气干燥的时候不松散，行车时尘土少；下雨时能很快把水排干。这几个工程技术人员从来就没搞过路桥工程，梅晚晚上开了一个夜车把随身带来的课本和技术资料都复习了一遍。
-[y003]: /characters/y003 "王洛宾"
+In contrast, the work on the road surface was more complicated. A dirt road surface was required to be flat and dense, not loose when the weather was dry, and with little dust when driving; and it should be able to drain water quickly when it rained. None of these engineering and technical personnel had ever worked on road and bridge projects. Mei Wan stayed up all night to review the textbooks and technical materials he had brought with him.
+[y003]: /characters/y003 "Wang Luobin"
