--- a/_posts/2009-11-8-2-02200.md
+++ b/_posts/2009-11-8-2-02200.md
@@ -1,101 +1,101 @@
 ---
 layout: post
-title: 第二十二节 黄大户
+title: Section 22: Huang Dahuhu
 category: 2
 path: 2009-11-8-2-02200.md
 tag: [normal]
 ---
 
-　　吴明晋一时失色，心里十分的感动，他知道这位黄大户因为急公好义，地方每有匪患往往都会带族人乡勇出力剿灭，已经失去过好几个近支本房的子侄，却没想到这次连儿子都死了一个。
+Wu Mingjin was momentarily taken aback, and his heart was deeply moved. He knew that this Huang Dahuhu, out of a sense of public duty, would often lead his clansmen and local braves to fight against bandits whenever there was trouble in the area. He had already lost several close nephews, but he never expected to lose a son this time.
 
-　　“请老先生节哀。贼人退后，学生自当奏报上官，为贵公子请抚恤荣典。”黄大户没有功名，不过他有儿子是秀才，吴大令又有意高抬他，平日里便叫他一声“老先生”。
+"Please accept my condolences, old sir. After the bandits retreat, I will report to my superiors and request a posthumous honor for your esteemed son." Huang Dahuhu had no official rank, but his son was a xiucai, and Magistrate Wu intended to elevate him, so he usually addressed him as "old sir."
 
-　　“犬子是为平靖地方而没的。我黄家世受国恩，自当粉身碎骨报效朝廷、保卫桑梓，并不贪恋这恤身荣典。”黄守统不愿意多谈儿子的事情——他虽有三个儿子，这个即是庶出又没功名，但是丧子之疼依然是摧心裂肺一般。
+"My son died for the peace of the region. My Huang family has received the grace of the state for generations, and we should sacrifice ourselves to repay the court and protect our homeland. We do not covet this posthumous honor." Huang Shoutong was unwilling to talk much about his son—although he had three sons, this one was born of a concubine and had no official rank, but the pain of losing a son was still heart-wrenching.
 
-　　“守统此来，是向明府告警的。”他开门见山地说道，“此次海贼不比往常，我临高将有大难了！”
+"I have come this time to warn you, magistrate," he said, getting straight to the point. "These sea pirates are different from the usual ones. My Lingao is about to face a great disaster!"
 
-　　“老先生何出此言？”吴明晋大吃一惊，他知道这位老人沉静坚韧，不是空口大话之人。
+"Why do you say that, old sir?" Wu Mingjin was greatly alarmed. He knew that this old man was calm and tenacious, not one to make empty boasts.
 
-　　黄守统便把昨日他儿子带着十来个乡勇在百人头滩附近伏击三个海贼探子的情况说了一遍。他自己虽没参加，但是逃回来的乡勇的描述让他十分吃惊，一轮弓箭袭击只射倒一个，虽说老话三箭不如一刀，乡勇用的弓又不好，但是对方身无甲胄，二个大汉都中了七八箭还能一路冲杀，连杀数人，最后把他儿子也给杀了。
+Huang Shoutong then recounted the situation of his son leading a dozen local braves to ambush three pirate scouts near Bairen Tan the day before. Although he did not participate himself, the description of the returning local braves shocked him. A round of archery only brought down one of them. Although the old saying goes that three arrows are not as good as one sword, and the bows used by the local braves were not good, the other side had no armor. Two big men were hit by seven or eight arrows and could still charge all the way, killing several people in a row, and finally killing his son.
 
-　　他闭起眼睛，想起乡勇把儿子的尸体带回来后的惨状，半个脸颊几乎被打碎，一只眼睛不知去向，听乡勇说整个过程，这个人身中数箭又被乡勇围打，自小喜欢舞枪弄棒的儿子在他手中只有一个回合即被击毙，此等人物即使在官军里也是少有的猛将了。
+He closed his eyes and recalled the tragic state of his son's body when the local braves brought it back. Half of his cheek was almost shattered, and one eye was missing. Hearing the local braves describe the whole process, this person was hit by several arrows and surrounded by the local braves. His son, who had loved to practice martial arts since he was a child, was killed in a single round. Such a person was a rare fierce general even in the official army.
 
-　　单是个人的武勇，他还不甚担心，但是乡勇拿回来的另一样东西却让他很担忧。
+He was not very worried about individual bravery, but another thing that the local braves brought back made him very worried.
 
-　　“海贼火器十分厉害，内中一人用一支小手铳，连杀数人，连子药都不装。明府请看——”说着他将怀里一个布包递了过来，吴明晋打开一看，里面是乌蓝色的一块铁，模样很小巧，从样式来看略似红毛人用的手铳，但是外表简洁，没有多余的线条，也不见夹火绳的地方。
+"The pirates' firearms are very powerful. One of them used a small handgun to kill several people in a row without even loading powder and shot. Please take a look, magistrate—" As he spoke, he handed over a cloth-wrapped bundle from his bosom. Wu Mingjin opened it and saw a dark blue piece of iron inside. It was very small and exquisite. From the style, it slightly resembled the handguns used by the red-haired people, but its appearance was simple, with no extra lines, and no place for a matchlock.
 
-　　“这是手铳？”
+"This is a handgun?"
 
-　　“正是，”看到吴大令一脸疑惑，黄守统说这是乡勇在事后返回战场时拣到的，大约海贼在混战中所失落。
+"Exactly," seeing Magistrate Wu's puzzled expression, Huang Shoutong said that this was picked up by the local braves when they returned to the battlefield afterwards. It was probably lost by the pirates in the melee.
 
-　　“这个，乡勇所说可信么？”吴大令还是不大相信，他是个文人，但是最近二十年来文人士大夫都好谈兵谈火器，各种火铳虽没都见过实物，图样总还是书上见识过的。这东西和任何火铳都不沾边，除了也有一个枪口、一个扳机。
+"Is what the local braves said credible?" Magistrate Wu was still not very convinced. He was a scholar, but in the past twenty years, scholars and officials had all been fond of talking about military affairs and firearms. Although he had not seen all kinds of firearms in person, he had seen their drawings in books. This thing did not resemble any firearm, except that it also had a muzzle and a trigger.
 
-　　【注：明晚期在知识分子中有过一个火器火药论述的高潮，多数人当然只是纸上谈兵的，宋应星在《天工开物》里批评过这一风气】
+[Note: In the late Ming Dynasty, there was a climax of discussion on firearms and gunpowder among intellectuals. Of course, most people were just armchair strategists. Song Yingxing criticized this trend in his "Tiangong Kaiwu".]
 
-　　“可信，此铳不用装药，扣下扳机即可发射。”黄守统拈须道，“拿回来之后我曾试发一枪，威力颇可观，五丈之外的厚木炮子亦可入，但再射则不发火。想是在这铳中预储多份子药的，扣扳机一次即发射一份。”
+"It's credible. This gun doesn't need to be loaded with powder. You can fire it by pulling the trigger." Huang Shoutong stroked his beard and said, "After I brought it back, I tried to fire it once. The power is quite considerable. It can penetrate a thick wooden target from five zhang away, but it won't fire again. I think there are multiple charges of powder and shot pre-stored in this gun, and one charge is fired each time the trigger is pulled."
 
-　　“那端得是威力极大之物了。”吴明晋看着眼前这支乌蓝色的小物件，忧心忡忡。如果海贼们有许多这样的火铳，野战民壮乡勇的弓箭如何抵御得了，看来还是依仗火炮守城才是上策。
+"Then it is a very powerful weapon." Wu Mingjin looked at the small, dark blue object in front of him with a worried expression. If the pirates had many such firearms, how could the bows and arrows of the local militia and braves resist them? It seemed that relying on cannons to defend the city was the best policy.
 
-　　“我这次来县里，一是为告警，二则也请明府拨给些器械。”
+"I came to the county this time, first to give a warning, and second to ask the magistrate to allocate some equipment."
 
-　　他现在身为六村联保的团总，手下好几百丁壮，武器却紧缺，除了大小头目和部分家丁有刀枪之外，一般乡勇只有木棍。临高本来铁器就缺乏，武器更少，他家家丁用的刀枪还是多年前祖辈留下来的。弓箭虽然有不少，但海南气候本身对弓箭不利，用起来并不称手。
+He was now the head of the six-village joint defense, with several hundred able-bodied men under his command, but he was short of weapons. Except for the leaders and some of his retainers who had swords and spears, the ordinary local braves only had wooden clubs. Lingao was originally lacking in ironware, and even more so in weapons. The swords and spears used by his family's retainers were left over from his ancestors many years ago. Although there were many bows and arrows, the climate of Hainan itself was not conducive to bows and arrows, and they were not easy to use.
 
-　　吴明晋不便推辞，便从武库里拨给他腰刀二十把，挨牌十面，虎叉四十根，铁枪五枝，又给了他一些火药铁子——黄家寨里有些铁炮抬枪，只是火药是官府的禁物，置备困难。
+Wu Mingjin could not refuse, so he allocated twenty waist swords, ten shields, forty tiger-head tridents, and five iron spears from the armory. He also gave him some gunpowder and iron shot—there were some iron cannons and swivel guns in Huang Family Village, but gunpowder was a prohibited item by the government, and it was difficult to obtain.
 
-　　黄守统正待告辞下去休息，门子来报，早晨出去侦察的探子回来了。从海贼登陆开始，县每天都派出一批探子去打探情况，这些人都是本地出身，地形路径熟悉。
+Just as Huang Shoutong was about to take his leave and rest, the gatekeeper came to report that the scouts who had gone out to scout in the morning had returned. Since the pirates landed, the county had sent out a batch of scouts every day to gather information. These people were all locals and were familiar with the terrain and paths.
 
-　　城上不敢开门，只把预备好的大箩筐放下去，将人拉上城来。探子们每天都出去，并无损伤，今天回来却十分的惊惶。城上的民众见他们如此模样，议论纷纷。
+They did not dare to open the city gate, but only lowered the prepared large basket to pull the people up to the city. The scouts went out every day without any damage, but today they returned in great panic. The people on the city wall saw their appearance and talked about it.
 
-　　“什么，修路？”吴大令惊讶地问道。
+"What, building a road?" Magistrate Wu asked in surprise.
 
-　　“是，老爷。”探子跪在地上，偷偷得望了老爷一眼。
+"Yes, my lord." The scout knelt on the ground and secretly glanced at the magistrate.
 
-　　“是从博铺向百人头滩修。沿途都有标记。海贼们堆土为路。已经修了差不多五六里了。”
+"They are building from Bopu to Bairen Tan. There are markers along the way. The pirates are piling up earth to make a road. They have already built about five or six li."
 
-　　“五六里路，你没看错？！”黄守统向前一冲，逼问道。
+"Five or six li of road, you didn't see it wrong?!" Huang Shoutong rushed forward and demanded.
 
-　　“小的没有看错。”探子畏惧了看了一眼这个在临高赫赫有名的人物。
+"I did not see it wrong." The scout looked fearfully at this famous figure in Lingao.
 
-　　黄守统十分惊诧，他回过头拱手禀道：“明府，本寨的乡勇昨天去厮杀，沿途尚未见有路……”
+Huang Shoutong was very surprised. He turned his head and cupped his hands in a salute, saying, "Magistrate, the local braves of my village went to fight yesterday, and there was no road along the way..."
 
-　　吴明晋点点头，沉声道：“修路之事确系眼见，未有夸大之处？若有半点虚言，定不饶尔！”
+Wu Mingjin nodded and said in a deep voice, "Is the matter of road construction really what you saw with your own eyes, without any exaggeration? If there is half a word of falsehood, I will not spare you!"
 
-　　探子连连磕头：“小的不敢诓骗老爷，确系已修路五六里。”他又说海贼们有邪术，许多车子无轮也可走，上有巨大的铁膊，能用使巨铲挖土，小山般的泥土轻轻松松就能挖出搬运……
+The scout kowtowed repeatedly, "I dare not deceive you, my lord. They have indeed built five or six li of road." He also said that the pirates had evil arts. Many of their carts could move without wheels, and they had huge iron arms that could dig up earth with giant shovels. They could easily dig up and transport small hills of earth...
 
-　　又是邪术！吴大令不信怪力乱神的说法，但是海贼们超越他理解范围的东西越来越多，能力也越来越大，这实在让他担心。就说这修路，县里修桥补路的事情，他不是没想过，但是每每总是为各种各样的事情制肘，不是缺钱征集不了民工，便是土地上的地主吵闹，不肯让地。就是一切顺利，他也没本事二天之内就修出五六里大路来——还是堆土成路。这群海贼到底是什么样的人物呢？
+Evil arts again! Magistrate Wu did not believe in supernatural things, but the pirates had more and more things that were beyond his comprehension, and their abilities were getting stronger and stronger, which really worried him. Take this road construction, for example. He had thought about repairing bridges and roads in the county, but he was always constrained by various things. Either he lacked money and could not recruit civilian laborers, or the landlords on the land would make a fuss and refuse to give up their land. Even if everything went smoothly, he would not be able to build five or six li of road in two days—and it was a road made of piled earth. What kind of people were these pirates?
 
-　　然而此时的问题不在于路，而是海贼为何修路，既然是匪，就不可能是为了积功德；他们意在抢劫，这么做是多此一举。再说百人头滩有什么好抢的，那里只有几家石匠而已，现在多半都已逃走了。
+However, the problem at this time was not the road, but why the pirates were building a road. Since they were bandits, it could not be for accumulating merit; their intention was to rob, so this was superfluous. Besides, what was there to rob at Bairen Tan? There were only a few stonemasons there, and most of them had probably fled by now.
 
-　　犹疑中赶紧吩咐将县衙内的官员、刘大霖和来增援的百户都请来，大家一同商议对策。听完探子和黄大户的情况，一厅官绅都默不作声。本来他们以为海匪登陆，再坏还能坏到哪去，最多抢掠百姓，烧掉几个村庄墟市。本县自宋以来，无论黎民暴动还是海匪劫掠，从没给攻陷过。有人还庆幸这群海匪是中秋过后登陆，若是在立冬前秋粮登场之时，恐怕损失要惨重的多。然而这几天坏消息一个接一个，先是探子回报对方在博铺扎下大营，日夜向岸上卸载货物。接着就是向来以勇悍敢战著称的黄家寨乡勇溃败，现在海贼们居然又在修路，谁都闹不清这伙髡发之徒到底想干什么。
+In his hesitation, he quickly ordered the officials in the county yamen, Liu Dalin, and the centurion who had come to reinforce them to be invited to discuss countermeasures together. After hearing the situation from the scout and Huang Dahuhu, the officials and gentry in the hall were all silent. They had originally thought that if the sea bandits landed, how bad could it be? At most, they would plunder the common people and burn down a few villages and market towns. Since the Song Dynasty, this county had never been captured, whether it was by the Li people's rebellion or by the plunder of sea bandits. Some people were even glad that this group of sea bandits landed after the Mid-Autumn Festival. If it were before the winter solstice when the autumn grain was harvested, the losses would probably be much more severe. However, in the past few days, bad news came one after another. First, the scouts reported that the other side had set up a large camp at Bopu and was unloading goods onto the shore day and night. Then, the Huang Family Village local braves, who had always been known for their bravery and fighting spirit, were defeated. Now the pirates were even building a road. No one knew what this group of髡发之徒 (kun fa zhi tu - people with cut hair) wanted to do.
 
-　　吴明晋望着依为高参的刘大霖：“老先生怎么看？”
+Wu Mingjin looked at Liu Dalin, whom he relied on as a senior advisor, "What do you think, old sir?"
 
-　　刘进士以手支额，半晌才道：“明府，此事有大凶险。”
+The Jinshi Liu supported his forehead with his hand and said after a long while, "Magistrate, this matter is of great danger."
 
-　　在场的吴大令和吴亚都吃了一惊，吴大令忙拱手道：“请老先生教我。”
+Magistrate Wu and Wu Ya who were present were both startled. Magistrate Wu hurriedly cupped his hands and said, "Please teach me, old sir."
 
-　　“恐此髡发海贼的意图是攻城！”
+"I'm afraid the intention of these髡发 (kun fa - cut hair) sea pirates is to attack the city!"
 
-　　“何以见得？”
+"How can you tell?"
 
-　　“山贼海匪多为轻装抄掠，何需修路？若是修路，唯一之解，便是意图攻城了。大霖以为，海贼必携有攻城器械，十分沉重，不修路便不得运抵城下。”
+"Mountain bandits and sea pirates mostly engage in light raids. Why would they need to build a road? If they are building a road, the only explanation is that they intend to attack the city. I believe that the pirates must have siege equipment that is very heavy, and they cannot be transported to the city without building a road."
 
-　　要修路才能运到城下的攻城器械，那得多大多重的物件？上下众人顿时鸦雀无声。吴明晋颤声道：“莫非是红夷大炮……”
+Siege equipment that required a road to be transported to the city, how big and heavy would that be? Everyone in the hall was suddenly silent. Wu Mingjin said with a trembling voice, "Could it be... Hongyi cannons..."
 
-　　“除此之外，难有他想。”
+"Besides that, it's hard to think of anything else."
 
-　　海南地近广东、澳门，红毛夷的船只时有路过，朝廷在广州向红毛人买大炮的事情，官场上也是有所闻的。吴明晋知道此炮十分沉重，但是威力惊人，朝廷都用在辽东守御。去年广宁之围便是依赖此炮才得以坚守，堪称军中利器。
+Hainan is close to Guangdong and Macau, and the ships of the red-haired foreigners often pass by. The court's purchase of cannons from the red-haired people in Guangzhou was also heard of in official circles. Wu Mingjin knew that this cannon was very heavy, but its power was amazing, and the court used it for the defense of Liaodong. The siege of Guangning last year was successfully defended thanks to this cannon, which can be called a sharp weapon in the army.
 
-　　眼下若是有这么个玩意拉到城下——吴大令不敢想象会有什么样的结果。
+If there was such a thing pulled to the city now—Magistrate Wu dared not imagine what the result would be.
 
-　　“这可如何是好？本县只是一座小城而已。”吴亚早就惊得叫了起来，其实他言下之意在座的官绅们都明白，临高这个边鄙小城有什么值得海贼们如此兴师动众的东西？临高造了什么孽，要招来红夷大炮这等杀器。
+"What should we do? This county is just a small city." Wu Ya had already cried out in alarm. In fact, all the officials and gentry present understood his underlying meaning. What was there in this remote and small city of Lingao that was worth the pirates making such a big fuss? What sin had Lingao committed to attract such a killer weapon as the Hongyi cannon?
 
-　　他们此时还不知道要面对的是比红夷大炮更妖孽的事物，正如后来临高城内的百家书场里说书人口头禅：“悲剧啊！”
+They did not know at this time that they were about to face something even more monstrous than the Hongyi cannon. As the catchphrase of the storytellers in the hundred schools of storytelling in Lingao City later went: "Tragedy!"
 
-　　众人都将目光投向身穿鸳鸯站袄的孙百户，这位世袭百户本以为这是件好差使，到得城里下马伊始便收了十两银子的犒劳，县里发给士兵的犒劳又被他搜刮去一半。这二天顿顿酒肉，比起卫所里那半死不活的日子舒坦多了，至于海贼攻城，他觉得这是不可能的事情。
+Everyone turned their eyes to Centurion Sun, who was wearing a mandarin duck standing robe. This hereditary centurion had originally thought this was a good assignment. As soon as he got off his horse in the city, he received a reward of ten taels of silver. He also skimmed off half of the reward given to the soldiers by the county. For the past two days, he had been eating and drinking well, which was much more comfortable than the half-dead days in the garrison. As for the pirates attacking the city, he felt that it was impossible.
 
-　　眼见一堂人都看着他，不由得心慌起来。他深知自己虽顶个世袭百户的名头，实际就是个小地主，带来的三十个大头兵，捏锄头的日子比拿刀枪的日子多。唯一有点威力的就是那门佛郎机炮，要他拿对策如何拿得出？再说海匪们真要拖来了红夷大炮，他逃命还来不及。心知说什么都不好，干脆故作镇定一言不发。
+Seeing that everyone in the hall was looking at him, he couldn't help but panic. He knew very well that although he had the title of a hereditary centurion, he was actually just a small landlord. The thirty soldiers he brought with him spent more time holding hoes than swords and spears. The only thing that had some power was that Franc-gun. How could he come up with a countermeasure? Besides, if the sea bandits really dragged over the Hongyi cannons, he would be too busy running for his life. Knowing that it was not good to say anything, he simply pretended to be calm and said nothing.
 
-　　吴县令暗骂孙百户是个废物，不过他本来也没太指望卫所兵能有什么作为。恐怕这事情还是得请汤将军出兵了。
+Magistrate Wu cursed Centurion Sun as a good-for-nothing in his heart, but he had not expected the garrison soldiers to be of much use anyway. He was afraid that he would have to ask General Tang to send troops for this matter.
 
-　　“眼下之计，唯有袭扰之策了。”刘大霖道，“髡贼们筑路总不能时时都聚在一起，我们多派乡勇，许以重赏，或以弓箭袭扰，或乘隙纵火，日夜袭扰使其不得安生。必能阻其修路。”
+"The only strategy now is to harass them," Liu Dalin said. "The髡贼 (kun zei - cut-hair bandits) can't always be gathered together when they are building the road. We should send more local braves, promise them heavy rewards, either harass them with bows and arrows, or set fire to them when there is an opportunity. Harass them day and night so that they can't rest. This will surely hinder their road construction."
