--- a/_posts/2009-11-9-2-02300.md
+++ b/_posts/2009-11-9-2-02300.md
@@ -1,76 +1,76 @@
 ---
 layout: post
-title: 第二十三节 邬德的新任务（一）
+title: Section 23: Wu De's New Task (Part 1)
 category: 2
 path: 2009-11-9-2-02300.md
 tag: [normal]
 ---
 
-　　官绅们还是不放心，便叫人送了一封书子去琼山的汤参将，试探下能否请动来剿匪。
+The officials and gentry were still not at ease, so they sent a letter to General Tang in Qiongshan to see if they could persuade him to come and suppress the bandits.
 
-　　刘进士寄予厚望的袭扰战术却得不到各村寨乡勇团总的支持。乡勇们并不愿意打仗，大家听说黄家寨的乡勇在众寡悬殊又是伏击战的情况下都吃了败仗，士气更是低落。
+However, the harassment tactics that Jinshi Liu had high hopes for did not receive the support of the local braves and militia leaders from the various villages. The local braves were not willing to fight. Everyone had heard that the local braves of Huang Family Village had been defeated even in an ambush with a numerical advantage, and their morale was even lower.
 
-　　吴大令又是恐吓，又是许愿，各家的乡勇还是不愿去，他们也存着个想头：这群人上岸来也没见他们抢劫杀人烧房子的，就算要修路攻城也是打县城，与他们何干？自己去打了，反而把海贼们激怒招来报复怎么办？乡勇们家都在农村，不比老爷们可以躲在城里。被逼不过勉强去了，远远的转个圈便回来，至于各村寨的团总，只要不是家宅产业不在县城附近的，对此都不太热心，乡勇不是同乡同宗，就是自己家的佃户长工，万一打仗送了命地让谁种？临高缺得就是劳力，所以也并不认真督责乡勇们去厮杀。
+Magistrate Wu both threatened and made promises, but the local braves of the various families were still unwilling to go. They also had a thought: these people came ashore and they haven't seen them robbing, killing, or burning houses. Even if they want to build a road to attack the city, they are attacking the county town, what does it have to do with them? If they go to fight, what if they anger the sea pirates and invite retaliation? The homes of the local braves are all in the countryside, unlike the masters who can hide in the city. When forced, they would reluctantly go, make a circle from a distance, and then come back. As for the militia leaders of the various villages, as long as their homes and properties were not near the county town, they were not very enthusiastic about it. The local braves were either from the same village or clan, or they were their own tenant farmers and long-term laborers. If they died in battle, who would cultivate the land? What Lingao lacked was labor, so they did not seriously supervise the local braves to fight.
 
-　　乡勇们频繁在工地沿线出现的情况引起了派出去的侦察员的注意。军事组人员因为海滩营地已经成型，毋需太多的警卫，除了在临高县城下保留一个三人观察哨之外，便将其他成员都投入到筑路工地的警卫中去了。
+The frequent appearance of local braves along the construction site attracted the attention of the dispatched scouts. The military group personnel, because the beach camp had already taken shape and did not need too many guards, except for maintaining a three-man observation post under Lingao County, they put all other members into the security of the road construction site.
 
-　　沿着路段，筑路路段上每隔3公里修筑一个瞭望塔楼，每个塔楼都由配备高倍望远镜和步话机的瞭望哨警戒。塔楼下面则是警卫组建造的简易工事，一人高的土墙，外面再围上铁丝网，工事里有四驱农用车和摩托车，还有一部硅2瓦电台。平时用摩托车在工地沿线各点之间来回巡逻，一旦发现某处发现敌人袭击，就以农用车作为快速投送工具运送战士增援。
+Along the road section, a watchtower was built every 3 kilometers on the road construction section. Each tower was guarded by a watchman equipped with high-power binoculars and a walkie-talkie. Below the tower was a simple fortification built by the guard group, with a one-man-high earthen wall, surrounded by barbed wire. Inside the fortification were four-wheel-drive agricultural vehicles and motorcycles, as well as a 2-watt silicon radio. Motorcycles were usually used to patrol back and forth between various points along the construction site. Once an enemy attack was discovered somewhere, the agricultural vehicles would be used as a rapid deployment tool to transport soldiers for reinforcement.
 
-　　仅仅有战士是不够的，还得发动群众。施工队配发了一批SKS步枪和弹药，保证在每个工作点除了1名军事组警卫之外有4－5名武装工人，一旦发生突发性的袭击事件，作业点上可以自我保护。
+Just having soldiers was not enough, the masses had to be mobilized. The construction team was issued a batch of SKS rifles and ammunition to ensure that at each work point, in addition to 1 military group guard, there were 4-5 armed workers. In the event of a sudden attack, the work point could protect itself.
 
-　　“一旦你们被袭击，不要乱动乱跑，报告之后就地开火，明白吗？”何鸣叮嘱工地上各个点的负责人，“机动队五分钟内必到。别的点被袭击你们只需要及时报告就可以。”
+"Once you are attacked, don't move around randomly. After reporting, open fire on the spot, understand?" He Ming instructed the person in charge of each point on the construction site. "The mobile team will arrive within five minutes. If other points are attacked, you only need to report in time."
 
-　　这样一来小股来侦察的乡勇在白天甚至都无法靠近工地，一发现有任何可疑人物靠近，马上通报到工地指挥部，指挥部就会调度巡逻的越野摩托车过去查看。警卫们甚至不用开枪，摩托车开动起来的轰鸣就足以让对方落荒而逃了。开摩托车的队员一时兴起甚至能追出很远，直到对方跑得脱力倒下，再把人抓回来——要不是北炜担心这样会被敌人诱伏，严禁他们追击，还能多抓几个。一审问却是叽里呱啦的语言不通，问不出什么，用电台把熊卜佑叫来了当翻译官，幸好临高话的几百年来变化不大，折腾一番之后总算明白了他们是奉命来侦察的，除此之外就是老一套的上有八十老母，下有八岁幼子之类的哀求饶命的话。
+In this way, small groups of local braves who came to scout could not even get close to the construction site during the day. As soon as any suspicious person was found approaching, it would be immediately reported to the construction site headquarters, and the headquarters would dispatch patrolling off-road motorcycles to check. The guards didn't even need to open fire. The roar of the motorcycles was enough to make the other side flee in panic. The motorcycle team members, on a whim, could even chase for a long distance until the other side was exhausted and fell, and then capture them—if it weren't for Bei Wei's worry that this would lead to an enemy ambush and strictly forbid them from pursuing, they could have captured a few more. During the interrogation, they spoke an incomprehensible language and couldn't get anything out of them. They used the radio to call Xiong Buyou to be a translator. Fortunately, the Lingao dialect had not changed much over the past few hundred years. After some effort, they finally understood that they were ordered to scout. In addition, it was the old story of having an eighty-year-old mother at home and an eight-year-old child below, begging for mercy.
 
-　　从俘虏口中穿越者大体知道以为他们修路的举动县城里已经慌作一团，日夜预备着他们攻城。修路能让人害怕这让执委会有点意外，原先预计城里多少会有些驱逐他们的准备，显然临高的大明官绅们更怕他们，这个第一手资料给了执委会很大的信心。
+From the captives, the transmigrators roughly knew that the county town was in a panic because of their road construction, and was preparing for them to attack the city day and night. The fact that road construction could scare people surprised the Executive Committee a little. They had originally expected that the city would have some preparations to expel them. Obviously, the Ming officials and gentry of Lingao were more afraid of them. This first-hand information gave the Executive Committee a lot of confidence.
 
-　　俘虏因为人数太少，本来打算干脆放走，但是执委会认为这是一个机会，可以作为将来大规模接受使用当地劳动力的一个演习。就被全部留下了。
+Because the number of captives was too small, they were originally planned to be released. However, the Executive Committee believed that this was an opportunity that could be used as a drill for the large-scale acceptance and use of local labor in the future. So they were all kept.
 
-　　随着闹钟的“铃铃”声，把邬德从睡梦中叫醒了，一看钟，早上9点。
+With the "ring-ring" of the alarm clock, Wu De was awakened from his sleep. He looked at the clock, it was 9 am.
 
-　　昨天值夜到凌晨4点才睡觉，现在几乎连眼睛也睁不开，不过来到古代不是来度假，是来“讨生活”的，再睡下去，恐怕到时候连饭也没得吃了。
+He was on duty until 4 am yesterday and only then went to sleep. Now he could barely open his eyes. But he came to ancient times not for a vacation, but to "make a living." If he slept any longer, he was afraid that he would not even have food to eat.
 
-　　邬德作为渔船支队的指挥，本来是可以睡在条件更好的渔船上的，但是军事组眼下人手吃紧，海军系统的人也得上阵，只好上岸来了。
+As the commander of the fishing boat detachment, Wu De could have slept on the better-conditioned fishing boats, but the military group was short of manpower, and the navy personnel also had to go to the front, so he had to come ashore.
 
-　　在部队多年，从小又是渔家出身，转业后虽然在城市工作，但是丰富的经历给了他许多生活经验。执委会统一搭建的帐篷他嫌太小，人又住得太拥挤。便和医疗组商量，在他们附近的树林里找了块空地清理干净，去伐木场找了10来根3米不到的长木棍，一头拿绳子扎牢，另一头撑开插进泥里，用油布把四周围上，留出一个口子出入，再在油布外面盖上芦苇，一个印地安型帐篷的雏形已经出现在众人面前了，然后在四周挖出排水沟，在帐篷里铺上沙子和草木灰，一个象样的窝就出现了。这里沿河靠海，环境不错，也能顺便看着他的四条渔船。
+He had been in the army for many years, and was from a fishing family since he was a child. Although he worked in the city after being transferred to civilian work, his rich experience gave him a lot of life experience. He found the tents uniformly set up by the Executive Committee to be too small and too crowded. So he discussed with the medical team, found a clearing in the woods near them and cleaned it up, went to the logging yard to find about 10 long wooden poles less than 3 meters long, tied one end with a rope, and spread the other end and inserted it into the mud. He surrounded it with oilcloth, leaving an opening for entry and exit, and then covered the outside of the oilcloth with reeds. The prototype of an Indian-style tent had already appeared in front of everyone. Then he dug drainage ditches around it, and spread sand and plant ash in the tent. A decent nest appeared. The environment here was good, along the river and by the sea, and he could also watch his four fishing boats.
 
-　　为了省油，渔船队的四艘船保留二艘处于随时出动的状态，另二艘船暂时封存。一艘用来捕鱼，龙豪湾这边的鱼虾资源很丰富，还能捞到海带之类可吃的海草类。[吴南海][y009]最近一直在渔船上跑来跑去，看到捞上来的东西就拍照，拿个小本记录。
+In order to save fuel, the four boats of the fishing boat team kept two in a state of being ready to be dispatched at any time, and the other two were temporarily sealed. One was used for fishing. The fish and shrimp resources in Longhao Bay were very rich, and they could also catch edible seaweeds such as kelp. [Wu Nanhai][y009] had been running around on the fishing boats recently, taking pictures of everything that was caught and taking notes in a small notebook.
 
-　　另一艘则作为备用，船上时刻都有一组人留守，准备随时应对来自海上的袭击。
+The other one was used as a spare. There was always a group of people on duty on the boat, ready to deal with attacks from the sea at any time.
 
-　　这条起身拿铝锅端了一锅草木灰去河边，搓把脸，折根嫩柳咬烂了当牙刷顺便把牙齿也搓一搓，昨天值夜班又修瞭望塔，晚上没用睡袋，身上已经开始酸了，鼻子塞住了，头也有些痛了。
+He got up, took an aluminum pot, and carried a pot of plant ash to the river. He washed his face, broke a tender willow branch, chewed it up as a toothbrush, and scrubbed his teeth. He was on duty last night and repaired the watchtower. He didn't use a sleeping bag at night. His body was already sore, his nose was stuffy, and his head ached a little.
 
-　　不会感冒了吧？脑子里浮现出了一个不好的念头。
+Could I have a cold? A bad thought appeared in his mind.
 
-　　摸摸额头，好像没有热度，还好。折了几跟柳条，剥下树皮，扔进嘴里嚼开了，柳树皮里富含水杨酸，虽然对胃有刺激，但是对付头痛脑热，确实很有有效果。
+He touched his forehead. It didn't seem to be hot. Fortunately. He broke a few willow branches, peeled off the bark, and threw it into his mouth to chew. Willow bark is rich in salicylic acid. Although it is irritating to the stomach, it is very effective for headaches and fevers.
 
-　　来到河边浴场脱光衣服就下了水，昨天太累了，根本没洗澡，以现在这种卫生条件，不勤洗澡的话，会得皮肤病的。这个纯天然露天澡堂是建筑组在D+1完成的另外一个民生工程——在河口附近选了一个水很浅的沙底河湾，湾口挂上用拦截网，再清理掉了里面的杂物淤泥，河岸上用从海滩上挖来的沙子铺上，本来还做个屏帐什么的，后来嫌麻烦就没做。每天五六点一下工，一群男人在里面赤条条乱哄哄的场面蔚为壮观。邬德因为是轮班执勤，没机会去凑这个热闹，据说男人赤条条的洗澡可以增进彼此的感情，什么时候也得和马委员他们一起洗个澡。
+He came to the riverside bathing place, took off his clothes, and went into the water. He was too tired yesterday and didn't take a bath at all. With the current sanitary conditions, if he didn't take a bath frequently, he would get skin diseases. This pure natural open-air bathhouse was another livelihood project completed by the construction team on D+1—they chose a shallow, sandy-bottomed river bay near the river mouth, hung an interception net at the mouth of the bay, and then cleaned up the debris and silt inside. The river bank was paved with sand dug from the beach. They originally wanted to make a screen or something, but later they found it too troublesome and didn't do it. Every day at five or six o'clock after work, the scene of a group of men bathing naked and chaotically in it was spectacular. Wu De, because he was on duty in shifts, had no chance to join in the fun. It is said that men bathing naked can enhance their feelings for each other. He would have to take a bath with Committee Member Ma and the others sometime.
 
-　　上午的水有些凉，邬德不禁打了个哆嗦。把身上和头发都打湿后，用带来的肥皂洗了头发和身子。洗完澡，用草木灰便把内裤和袜子洗了——这个是很要紧的卫生问题！他舍不得多用肥皂，虽然做肥皂不是什么高深工艺，但是看眼下这乱哄哄的状况短期内是不会有肥皂厂投产的，衣服拧干后就近晾在帐篷边的树上。
+The water in the morning was a bit cold, and Wu De couldn't help but shiver. After wetting his body and hair, he washed his hair and body with the soap he brought. After taking a bath, he washed his underwear and socks with plant ash—this was a very important hygiene issue! He was reluctant to use too much soap. Although making soap was not a high-level technology, looking at the current chaotic situation, there would be no soap factory in production in the short term. After wringing out the clothes, he hung them on a tree near the tent.
 
-　　营地的食堂是24小时供应的，他没兴趣去凑这个热闹。再说食堂里没什么值得一吃东西供应，无非是些海产品：海带汤、清水煮鱿鱼、清水煮贝类、清水煮大虾、清水煮螃蟹……基本全是清水煮海鲜，一开始大家饶有兴趣，为了螃蟹的大小问题还吵过架，连吃三四天之后都有点吃怕了的意思，昨天晚上有人煮了一锅方便面，居然引来了许多人垂涎欲滴的围观——不吃海鲜想吃方便面，真是此一时彼一时。
+The camp's canteen was open 24 hours a day, but he had no interest in joining the fun. Besides, there was nothing worth eating in the canteen, just some seafood: kelp soup, boiled squid, boiled shellfish, boiled shrimp, boiled crab... basically all boiled seafood. At first, everyone was very interested. They even argued over the size of the crabs. After eating it for three or four days in a row, they were a little tired of it. Last night, someone cooked a pot of instant noodles, which actually attracted many people to watch with drooling mouths—not eating seafood and wanting to eat instant noodles, it was really a different time.
 
-　　邬德倒不在乎拿海鲜当饭，只是鄙视食堂里做饭的家伙们乱来，把好东西都糟蹋了。他直接来到营地外面的一个海湾，岸边礁石上密密麻麻吸满了牡蛎和藤壶，好东西啊……拿出小刀，不多时就撬下几打，他也不多拿，这些贝类离水就死，死了就臭，臭了的家伙吃下去，拉肚子拉得昏天黑地，就算住医务室旁边也不能这么冒险。就直接坐在礁石上，三下五除二，撬开贝壳，把所有贝肉和汤水吃个干净，真鲜啊，养殖的家伙这这些比，逊的太多了。
+Wu De didn't care about eating seafood for meals, he just despised the guys in the canteen for messing around and ruining the good stuff. He went directly to a bay outside the camp. The reefs on the shore were densely covered with oysters and barnacles. Good stuff... He took out a small knife and pried off a few dozen in a short time. He didn't take much. These shellfish die as soon as they leave the water, and they stink when they die. Eating the stinky ones would cause diarrhea that would make you dizzy. Even if he lived next to the infirmary, he couldn't take such a risk. He sat directly on the reef, and in a few moves, he pried open the shells and ate all the meat and soup. It was so fresh. The farmed ones were far inferior to these.
 
-　　回到窝棚，从背包里拿出内裤穿好——穿这个还是因为海滩上多少会有些女人出没，不然还真想一丝不挂，身体干得快一些。保温杯里的水没有了，前几天都是自己烧水，从船上拉管子供应过来的机器冷凝水有股说不出的味道，幸好有些茶叶可以压一压。前几天开始食堂开始供水了，开水锅炉24小时供应是邬德最喜欢的服务，就是水里的漂白粉味道稍微重了点。
+He returned to the shed and took out his underwear from his backpack and put it on—he wore it because there were more or less some women on the beach. Otherwise, he would really want to be naked, so that his body would dry faster. The water in the thermos was gone. In the past few days, he had been boiling water himself. The machine condensate water supplied by a pipe from the ship had an indescribable taste. Fortunately, there was some tea to suppress it. A few days ago, the canteen started to supply water. The 24-hour supply of boiling water from the boiler was Wu De's favorite service, but the taste of bleach in the water was a bit strong.
 
-　　在伙房沏好一杯浓茶，感觉都惬意了许多——不知道临高产不产茶，即使不产茶，这么基本的作物农业组应该也有考虑吧？
+After making a cup of strong tea in the kitchen, he felt much more comfortable—he didn't know if Lingao produced tea. Even if it didn't, the agriculture group should have considered such a basic crop, right?
 
-　　“邬头，来块我们伙食办的最新产品吧？”伙头军拿来了一块黑漆漆的东西。
+"Chief Wu, would you like a piece of our food office's latest product?" The cook brought a black thing.
 
-　　“这是什么？”
+"What is this?"
 
-　　“烟熏鱼，这可是上等鱼肉，昨天在熏了一晚上。味道肯定好。”
+"Smoked fish. This is top-grade fish meat. It was smoked all night yesterday. The taste is definitely good."
 
-　　盛情难却，只好接了过来。这鱼肉被熏了一夜，水分和油几乎都被熏干了，外面黑忽忽的，摸上去硬帮帮的，卖相十分恐怖。
+It was hard to refuse his kindness, so he had to take it. The fish meat had been smoked all night, and the moisture and oil had almost been smoked dry. The outside was black, and it was hard to the touch. The appearance was very scary.
 
-　　鱼肉看着恐怖，吃着更恐怖，这所谓的烟熏鱼居然没用盐腌过就直接上架熏，熏的木头也不知道是什么玩意，吃到嘴里简直和刚才嚼的柳树没什么区别，就着刚泡好的热茶，才勉强咽下了去。
+The fish meat looked scary, and it tasted even scarier. This so-called smoked fish was actually smoked directly without being salted. He didn't know what kind of wood was used for smoking. It tasted almost the same as the willow he had just chewed. He barely swallowed it with the hot tea he had just made.
 
-　　吃完鱼，猛灌几口茶，才压下要呕吐的冲动。
+After eating the fish, he gulped down a few mouthfuls of tea to suppress the urge to vomit.
 
-　　“怎么，味道不错吧？”
+"Well, does it taste good?"
 
-　　“兄弟，你过去是干什么的？”邬德艰难的问。
+"Brother, what did you do in the past?" Wu De asked with difficulty.
 
-　　“我啊，学生物工程的，我叫胡仪成。”这个前伐木工人因为擅长动物解剖，混入了食堂继续练习他的解剖术。
-[y009]: /characters/y009 "吴南海"
+"Me? I studied bioengineering. My name is Hu Yicheng." This former lumberjack, because he was good at animal anatomy, had mixed into the canteen to continue practicing his anatomy skills.
+[y009]: /characters/y009 "Wu Nanhai"
