--- a/_posts/2009-8-20-0-00100.md
+++ b/_posts/2009-8-20-0-00100.md
@@ -1,48 +1,50 @@
 ---
 layout: post
-title: 关于本书﻿
+title: About This Book
 category: 0
 path: 2009-8-20-0-00100.md
 tag: [normal]
 ---
 
-　　作者：吹牛者
+Author: Chui Niu Zhe (The Braggart)
 
-　　这是一篇团穿的种田文。
+This is a "group transmigration" and "empire building" story.
 
-　　上班到现在，写得最多的是各式各样的报告，第一次写网络小说，有点底气不足。包括它是否会太监，自己也没有很大的把握。尽量努力有始有终吧。
+Since I started working, I've mostly written all sorts of reports. This is my first time writing a web novel, so I'm a bit lacking in confidence. I'm not even sure if I'll be able to finish it without abandoning it. I'll do my best to see it through to the end.
 
-　　这本书的由来，不多说了，知道的人一看就知道，这是某个论坛里的跑团活动的副产品。当年对这个活动很有兴趣，但是参与度不高，属于沉默的旁观者。
+I won't say much about the origin of this book. Those who know will know at a glance that this is a by-product of a role-playing campaign on a certain forum. I was very interested in the event back then, but my participation was low; I was a silent observer.
 
-　　活动中最大的一个感受就是，当大家的理想一致的时候，爆发出来的热情和力量是惊人的，当彼此的理念出现分歧，而矛盾又没有得到及时调和的时候，活动就开始慢慢的沉寂下去。
+My biggest feeling from the event was that when everyone's ideals are aligned, the enthusiasm and power that erupt are astonishing. When differences in ideas emerge and conflicts are not resolved in time, the event slowly begins to fall silent.
 
-　　难怪有人说过，团穿是穿越文的大忌，属于仆街的类别。
+No wonder some have said that group transmigration is a major taboo in the transmigration genre, a category destined for failure.
 
-　　不过，我依然想尝试一下。
+However, I still want to give it a try.
 
-　　PS：这本书，前后准备了差不多半年，包括搜集各种历史和技术资料。很幸运，手边有一些有利的条件，包括图书馆、学术网络，这些东西都大大丰富了我的资料。
+PS: I've spent about half a year preparing for this book, including collecting various historical and technical materials. Fortunately, I have some favorable conditions at hand, including libraries and academic networks, which have greatly enriched my resources.
 
-　　历史细节上，尽量做到可靠，不过因为资料来源广泛，自相矛盾之处很多，有时候为了情节需要或者无法查询具体资料，选择的史料难免会有出入。本人的历史功底也比较浅，出现问题在所难免，敬请指教。
+I've tried to make the historical details as reliable as possible. However, because the sources are wide-ranging, there are many contradictions. Sometimes, for the sake of the plot or when specific information is unavailable, the historical materials I choose may have discrepancies. My own historical knowledge is also rather shallow, so problems are inevitable. I welcome your corrections.
 
-　　本文以种田流为主，技术资料除了论文和专业书籍，主要来源是一些大跃进时期各种简易土法小册子，当时因为物质条件有限，简易制造和土法风行一时。技术方面的金手指肯定会开，呵呵，争取开得稍微能自圆其说一点。
+This novel is primarily in the "empire building" (种田流) genre. Besides academic papers and professional books, the main source of technical information comes from various pamphlets on simple, indigenous methods from the Great Leap Forward period. Due to limited material conditions at the time, simple manufacturing and local methods were all the rage. There will definitely be "golden fingers" (金手指, cheats or special abilities) in terms of technology, hehe. I'll try to make them somewhat self-justifying.
 
-　　故事情节，尽量的合理化，当然了，有些时候主角光环也是要开的，不然就没得混了。
+I'll try to make the plot as reasonable as possible. Of course, sometimes the "protagonist's halo" (主角光环, plot armor) will have to be activated, otherwise, there's no way to get by.
 
-　　愿意对情节、人物、技术方面提供意见和建议的朋友，请在书评区留言，感谢你们的支持。
+Friends who are willing to provide opinions and suggestions on the plot, characters, or technology, please leave a message in the review section. Thank you for your support.
 
-　　鸣谢
+**Acknowledgements**
 
-　　小说里一些故事情节和技术资料，都来自当年团穿的参与者们，无意独美，在此表示感谢，你们的创造力给了这部作品无限的生机和活力。
+Some of the plot points and technical information in the novel come from the participants of the original group transmigration campaign. I have no intention of taking sole credit. I want to express my gratitude here; your creativity has given this work infinite life and vitality.
 
-　　鸣谢：独孤求婚。概念首创者。
+Acknowledgements:
 
-　　东门吹雨、紫焱法师。最早的参与者。
+Dugu Qiuhun (独孤求婚). The originator of the concept.
 
-　　[文德嗣][y002]、[王洛宾][y003]、钟利时、[吴南海][y009]。技术和总体思路上给予了许多启发。
+Dongmen Chuiyu (东门吹雨), Ziyan Fashi (紫焱法师). The earliest participants.
 
-　　虫洞概念及虫洞的描写来自[文德嗣][y002]的《小职员穿越记》
+[Wen Desi][y002], [Wang Luobin][y003], Zhong Lishi (钟利时), [Wu Nanhai][y009]. They provided a lot of inspiration on technology and overall strategy.
 
-　　其他，不再一一列名了，欢迎大家来报名参与。有一部分ID我已经做了中文化，如果不想当龙套的或者对中文化名字不满的，请给我留言，我会修改的。谢谢。
+The concept of the wormhole and its description come from [Wen Desi][y002]'s "The Transmigration of a Minor Employee" (《小职员穿越记》).
+
+I won't list everyone else one by one. Everyone is welcome to sign up and participate. I have already sinicized some of the IDs. If you don't want to be a minor character or are not satisfied with the sinicized name, please leave me a message, and I will change it. Thank you.
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
 [y009]: /characters/y009 "吴南海"
