--- a/_posts/2009-8-21-0-00200.md
+++ b/_posts/2009-8-21-0-00200.md
@@ -1,30 +1,30 @@
 ---
 layout: post
-title: 封推感言
+title: Thoughts on Being Featured
 category: 0
 path: 2009-8-21-0-00200.md
 tag: [normal]
 ---
 
-　　承蒙读者和编辑的厚爱，《临高启明》终于上封推了。
+Thanks to the love of my readers and editors, "Lingao Qiming" has finally been featured on the front page.
 
-　　《临高启明》的写作到现在，已经持续了三个多年头了。回首以往，才发觉自己走过了这么长得道路，受到许多书友的欢迎。很欣喜也很惭愧。
+The writing of "Lingao Qiming" has been going on for more than three years now. Looking back, I realize that I have come such a long way and have been welcomed by so many book friends. I am very happy and also very ashamed.
 
-　　《临高启明》是我的第一部以娱乐性质为目的的作品，在此之前，我只是历史穿越类小说的爱好者，从来没有想过自己来写一部网络小说。
+"Lingao Qiming" is my first work for entertainment purposes. Before this, I was just a fan of historical transmigration novels and never thought of writing a web novel myself.
 
-　　从一时兴起的创作，发觉自己已经走上了一条不能回头的创作道路。期间的滋味很难用言语表达，用五味俱全亦无法表达我的全部感受。
+From a creation that started on a whim, I found that I had embarked on a creative path from which I could not turn back. The feelings during this period are difficult to express in words; even "a mixture of all flavors" cannot fully express all my feelings.
 
-　　因为是第一次撰写网络小说，对小说的节奏。人物塑造、桥段的把握都很生疏，有时候失之于拖沓生硬，有时候掌握不好故事的节奏，有时候前后时间段安排不好……这些都是临高写作中的问题。
+Because this is my first time writing a web novel, I am very unfamiliar with the rhythm of the novel, character development, and the handling of plot points. Sometimes it is too slow and stiff, sometimes I can't grasp the rhythm of the story, and sometimes the time periods are not well arranged... These are all problems in the writing of Lingao.
 
-　　有人对临高的评价是穿越技术手册，对此我欣然同意－－这或许也是《临高》的最大特色：在写《临高》时最希望能够尽量真实的模拟穿越者在新环境下要重建社会所面临的困难和所能采取的方法。当然，不管我们如何的想让故事“真实一些”，金手指依然是必不可少的。
+Some people have commented that Lingao is a "transmigration technical manual," and I readily agree with this--this may also be the biggest feature of "Lingao": when writing "Lingao," I most hoped to simulate as realistically as possible the difficulties that transmigrators would face in rebuilding society in a new environment and the methods they could adopt. Of course, no matter how much we want to make the story "more realistic," the "golden finger" is still indispensable.
 
-　　写作临高，对我个人来说，即使一种任务和负担，也是一次学习。如何复制一个工业社会？如何对社会进行改造？这些问题，都需要去查阅那些平日里根本不会触及的资料和书籍。大大开阔了我个人的眼界，可以说，通过创作临高，我收获良多。
+Writing Lingao, for me personally, is both a task and a burden, but also a learning experience. How to replicate an industrial society? How to transform society? These questions all require me to consult materials and books that I would never touch in my daily life. It has greatly broadened my horizons. It can be said that through the creation of Lingao, I have gained a lot.
 
-　　关于《临高启明》的由来，大家可能都知道是来自SC的一次群穿跑团活动。基本设定全部来自这次跑团的背景资料。此外，临高启明还从[文德嗣][y002]的《小职员穿越记》、绞线的《与宋同行》中汲取了许多创意和概念。
+Regarding the origin of "Lingao Qiming," everyone may know that it came from a group transmigration role-playing event on SC. The basic settings all come from the background materials of this role-playing game. In addition, "Lingao Qiming" has also drawn many creative ideas and concepts from [Wen Desi][y002]'s "The Transmigration of a Minor Employee" and Jiao Xian's (绞线) "Traveling with the Song Dynasty" (《与宋同行》).
 
-　　《临高启明》在创作中得到了许多书友的热心支持，特别是来自SC论坛和龙空LK的书友们的大力支持，他们为临高这部作品提供了大量的技术资料、历史背景材料、故事情节和创意。从某种意义上说，临高是集中了许多人心血的一部集体创作的作品。在此表示感谢。多谢大家长期以来对临高的支持。也希望书友们继续支持临高这部作品。
+During its creation, "Lingao Qiming" has received enthusiastic support from many book friends, especially the strong support from book friends on the SC forum and Longkong (LK) forum. They have provided a large amount of technical data, historical background materials, plot points, and creative ideas for the work of Lingao. In a sense, Lingao is a collective work that has concentrated the efforts of many people. I would like to express my gratitude here. Thank you all for your long-term support of Lingao. I also hope that book friends will continue to support the work of Lingao.
 
-　　感谢我的读者们，感谢起点。
+Thank you to my readers, and thank you to Qidian.
 
-　　因为本人工作的关系，长期以来临高的更新一直是3K党。暂时来说也不大可能有所改变，为了感谢起点和书友们的厚爱，在封推前后的一周时间内将每天更新5K。
+Due to my work, the updates for Lingao have long been around 3,000 characters per chapter. For the time being, this is unlikely to change. To thank Qidian and my book friends for their love, I will update 5,000 characters daily for the week before and after being featured.
 [y002]: /characters/y002 "文德嗣"
