--- a/_posts/2009-8-22-0-00300.md
+++ b/_posts/2009-8-22-0-00300.md
@@ -1,19 +1,19 @@
 ---
 layout: post
-title: 三江封推感言
+title: Sanjiang Front Page Feature Thoughts
 category: 0
 path: 2009-8-22-0-00300.md
 tag: [normal]
 ---
 
-　　三江有了大封推，本书轮到第一期，实在是荣幸之至。写书的时候纯属是一时兴起，没想到能走到这一步。
+It is a great honor that this book was featured in the first issue of Sanjiang's big front page promotion. When I started writing, it was purely on a whim, and I never expected to get this far.
 
-　　三年来的时间不长也不短，希望广大书友一如既往的支持启明，多多提供资料和创意。
+Three years is neither a long nor a short time. I hope that the majority of book friends will continue to support "Qiming" as always, and provide more materials and creative ideas.
 
-　　谢谢大家的支持。
+Thank you all for your support.
 
-　　喜欢本书的，愿意参与深度讨论的，请到SB论坛。www.架空区。
+For those who like this book and are willing to participate in in-depth discussions, please go to the SB forum. www.jiakongqu.
 
-　　谢谢大家
+Thank you everyone.
 
-　　三江大封推第一期http://sjg./Default.aspx
+Sanjiang's big front page promotion, first issue: http://sjg./Default.aspx
