--- a/_posts/2009-8-24-0-00500.md
+++ b/_posts/2009-8-24-0-00500.md
@@ -1,76 +1,76 @@
 ---
 layout: post
-title: 若干大结局
+title: Several Grand Finales
 category: 0
 path: 2009-8-24-0-00500.md
 tag: [normal]
 ---
 
-　　这是我在吹牛者电脑中黑到的《临高启明》大结局，大家看看就可，万万不可声张啊
+This is the grand finale of "Lingao Qiming" that I hacked from the author Chui Niu Zhe's computer. Everyone can take a look, but by all means, do not spread it around.
 
-　　《临高启明》大结局：
+**The Grand Finale of "Lingao Qiming":**
 
-　　话说穿越者们终于建国成功，和谐全世界。这天全体穿越者罕有地聚集于[马督公][y005]亲自设计的仿苏维埃宫的穿越宫，雄伟的穿越宫上暂时还空空如也，据说因为低估了[文总][y002]腰围，所以造成的铜像前重后轻，中宽下窄，现已重新回炉重塑。
+So, the transmigrators finally succeeded in founding their nation and bringing harmony to the whole world. On this day, all the transmigrators gathered, a rare occasion, in the Transmigration Palace, designed by Commissar Ma himself in the style of the Palace of the Soviets. The majestic Transmigration Palace was still empty for now. It was said that because they had underestimated Chief Wen's waistline, the bronze statue made of him was front-heavy, wide in the middle, and narrow at the bottom, and had been sent back to be recast.
 
-　　不过这并不妨碍穿越者们的庆功大会，所有的非穿越者们在摆好餐台后自动离场，空旷的大厅里只剩下穿越者们。餐台上摆满了各种想都想不到的精美食物，什么猩猩唇熊猫掌猎豹鞭巨鼋裙琳琅满目，各种名贵酒水从大厅正中喷泉喷涌而出。端的是酒池肉林纸醉金迷。穿越者们载歌载舞，为十年来穿越大业完美成功欢呼雀跃。也有的人想起半道崩沮的同志，不由得放声痛哭。大厅里好不热闹
+However, this did not hinder the transmigrators' celebration feast. All non-transmigrators automatically left after setting up the dining tables, leaving only the transmigrators in the vast hall. The tables were laden with all sorts of exquisite foods imaginable, a dazzling array of gorilla lips, panda paws, cheetah penises, and giant turtle skirts. All kinds of expensive wines gushed from a fountain in the center of the hall. It was truly a scene of debauchery with a pool of wine and a forest of meat. The transmigrators sang and danced, cheering for the perfect success of their ten-year transmigration enterprise. Some, however, thought of their comrades who had fallen along the way and could not help but weep aloud. The hall was a lively scene of chaos.
 
-　　欢声笑语中只有主席台上[马督公][y005]显得心事重重，酒食都是略沾唇即过，还不停用手按按胸口，硬硬的还在，心也缓缓的松松。[督公][y005]不由得想起三个月前[文总][y002]亲自交代的任务：搞一份穿越者利益分配的计划来，虽然不敢说要百分百通过，但[文总][y002]下的死命令是最少要有百分之八十以上穿越者同意才行。
+Amidst the laughter and cheers, only Commissar Ma on the main stage seemed preoccupied. He barely touched the food and wine, and kept pressing his chest. The hard object was still there, and his heart slowly relaxed. Commissar Ma couldn't help but think of the task Chief Wen had personally given him three months ago: to come up with a plan for the distribution of benefits among the transmigrators. Although he couldn't guarantee it would pass with 100% approval, Chief Wen's strict order was that at least 80% of the transmigrators had to agree.
 
-　　这几个月来[马督公][y005]不知渡过多少不眠之夜，原本稀疏的头发百不存一。而他胸袋内这份呕心沥血的方案等下拿出来到底有多少人通过，实在心里没底。
+For the past few months, Commissar Ma had spent countless sleepless nights, and his already sparse hair was almost all gone. He had no confidence in how many people would approve the painstaking plan in his breast pocket when he presented it later.
 
-　　[马千瞩][y005]还正心事重重时，一声巨响，跳上餐台跳哥萨克舞的席亚洲一头栽了下来，不等众人哄笑，只听到桌椅碟筷乱响，不知多少人纷纷倒地。有人惊呼“酒水有毒！”，登时全场大乱！
+While Ma Qianzhu was still lost in thought, with a loud crash, Xi Yazhou, who had jumped onto a dining table to do a Cossack dance, fell headfirst. Before the crowd could laugh, the sound of tables, chairs, dishes, and chopsticks clattering was heard, and countless people fell to the ground. Someone shouted, "The wine is poisoned!" and the whole place instantly descended into chaos!
 
-　　[督公][y005]心头剧震，忙行动真气，运起葵花宝典。只是不运功还好，一运功登时五脏六腑奇经八脉痛若刀铰，一口紫血喷射而出。这毒好生霸道，只呼吸功夫，放眼望去，全场竟然没一人能站的起来。
+Commissar Ma's heart trembled violently. He quickly circulated his true qi, activating the Sunflower Manual. But it would have been better if he hadn't. The moment he circulated his power, his five viscera and six bowels, and all his meridians felt as if they were being twisted by knives, and he spat out a mouthful of purple blood. This poison was incredibly potent. In the time it took to breathe, as far as the eye could see, not a single person in the entire hall could remain standing.
 
-　　只是....只是...
+But... but...
 
-　　只是[马公公][y005]左边还有一人负手傲然而立！
+But to Eunuch Ma's left, there was still one person standing proudly with his hands behind his back!
 
-　　“怎么是你”？
+"How can it be you?"
 
-　　那人不答，将手在桌角一按，登时呜呜声响，大厅中地板竟然从中间缓缓裂开，下面是个深不见底的大坑。随着地板的退后，桌椅和穿越者的尸体也随之滚落而下。
+That person did not answer. He pressed a corner of the table, and with a whirring sound, the floor of the great hall slowly split open from the middle, revealing a bottomless pit below. As the floorboards retracted, the tables, chairs, and the bodies of the transmigrators rolled down into it.
 
-　　[督公][y005]到底功力深厚，强压着毒力不致攻入心脉，还可端坐在椅中，只是动弹不得。想起穿越大业竟落入此人之手，不由得恨恨的说道：“我早在[文总][y002]你身边安插了无数细作，为何你还可以干出如此大事？我...我死不瞑目啊”
+Commissar Ma, with his profound power, managed to suppress the poison from reaching his heart, so he could still sit upright in his chair, though he couldn't move. Thinking that the great cause of transmigration had fallen into this person's hands, he couldn't help but say hatefully, "I planted countless spies around you, Chief Wen, how could you still pull off such a feat? I... I cannot die in peace!"
 
-　　[文总][y002]长笑一声，将手伸入颈下一拉，登时手中出现一张薄薄的人皮面具来，露出的却是另一张少见的胖脸。
+Chief Wen let out a long laugh, reached for his neck, and pulled. In his hand appeared a thin human-skin mask, revealing a different, rarely seen fat face.
 
-　　那胖子狞笑道：“我和[文总][y002]从来没有同时出现过，难道你们这些眼高于顶的高人却从来没发现过吗？”
+That fat man grinned sinisterly, "Chief Wen and I have never appeared at the same time. Have you high and mighty experts never noticed?"
 
-　　[马千瞩][y005]面如死灰，又是一口鲜血喷将出来，眼见地板退到自己脚下，意识模糊下口中只会大叫：“罢了！罢了！能死在坑王坑中也算有个交代了”
+Ma Qianzhu's face turned ashen. He spat out another mouthful of blood. Seeing the floor retract to his feet, his consciousness blurring, he could only shout, "So be it! So be it! To die in the Pit of the King of Pits is a fitting end!"
 
-　　看着空荡荡的大厅，胖子发出了毛骨悚然的狂笑，上前将“庆功大会”横幅上后两字一把撕下，露出了后面的“楼”字。门外，传来了“千秋万载，一统全球”的齐呼....
+Looking at the empty hall, the fat man let out a bloodcurdling, maniacal laugh. He went forward and tore off the last two characters from the "Celebration Feast" (庆功大会) banner, revealing the character "Tower" (楼) behind it, making it read "Qinggong Tower". From outside the door came the unified shout of "A thousand autumns, ten thousand generations, unify the globe!"...
 
-　　(全书完)
+(End of book)
 
-　　－－－－－－－－－－－－－－
+------------------------
 
-　　以上为“从天降鹰”（SB众）作品
+The above is the work of "Eagle from the Sky" (SB multitude)
 
-　　下面是YYYYY对这个结局的补充
+Below is YYYYY's addition to this ending
 
-　　太快了
+Too fast.
 
-　　学雍正吧
+Let's learn from Emperor Yongzheng.
 
-　　先是转心壶毒酒配毒鸽子，席亚洲等一干人贪吃，吃得太多，折损了
+First, the revolving heart pot with poisoned wine and poisoned pigeons. Xi Yazhou and a group of others were greedy and ate too much, so they were lost.
 
-　　剩下众人有没中毒的，也有中毒浅的
+Among the rest, some were not poisoned, and some were lightly poisoned.
 
-　　然后隐藏高手，P爷？等人仗一双宝掌呕血打伤女海盗，不过也毒发不治
+Then the hidden masters, P-ye? and others, with their pair of treasured palms, fought until they vomited blood and injured the female pirate, but they also succumbed to the poison and died.
 
-　　出楼是毒烟，又折损一批
+Leaving the tower, there was poison smoke, and another batch was lost.
 
-　　北纬等特战队一批人破机关折损了
+Bei Wei and a group of special forces were lost while breaking through the traps.
 
-　　。。。。。。。
+.........
 
-　　一共是十条毒计
+In total, there were ten deadly plots.
 
-　　最后逃出者[萧子山][y001]聊聊数人（作者开金手指了）但故事还远远没有结束，恩怨更没有结束
+In the end, the escapees, Xiao Zishan and a few others (the author used his golden finger), but the story was far from over, and the grudges were even further from being settled.
 
-　　剩余者聚在山上悼念死去的同志，这时候远处海面上冉冉升起了黎明的曙光，是在外执行任务的蒙德回来了
+The survivors gathered on a mountain to mourn their dead comrades. At this moment, the light of dawn slowly rose from the sea in the distance. It was Meng De, who had been on a mission outside, returning.
 
-　　“阿姆斯特丹，我会回来的”[萧子山][y001]临走时说
+"Amsterdam, I will be back," Xiao Zishan said before leaving.
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y005]: /characters/y005 "马千瞩"
