--- a/_posts/2009-8-25-0-00600.md
+++ b/_posts/2009-8-25-0-00600.md
@@ -1,100 +1,99 @@
 ---
 layout: post
-title: 张应宸的关于新道教的同人
+title: Zhang Yingchen's Fanfiction on the New Taoism
 category: 0
 path: 2009-8-25-0-00600.md
 tag: [normal]
 ---
 
-　　以下几篇均为龙空论坛盗泉子（书中龙套：张应宸）所作。临高新道教理念创始人：
+The following pieces were all written by Dao Quanzi (the in-book character: Zhang Yingchen) from the Longkong forum. He is the founder of the concept of Lingao's New Taoism.
 
-　　张应宸的日记摘要：
+**Excerpts from Zhang Yingchen's Diary:**
 
-　　大会即将召开，我连续几天造访了临高地区的寺庙。显然，临高地区的宗教活动尚未走上正轨，道教与佛教的教职人员在当地地位极低，这些教职人员本身也谈不上一个合格的宗教人员的素质。他们除了宣唱宝卷之外，基本缺乏正规宗教人员的素质，无论是放焰口还是拜忏，都不精通，其中有很大一部分还是文盲。
+The general meeting is about to be held. For several days, I have been visiting the temples in the Lingao area. It is clear that religious activities in Lingao have not yet been properly established. The status of Taoist and Buddhist clergy in the local area is extremely low, and the clergy themselves lack the qualities of a qualified religious professional. Apart from chanting scriptures, they basically lack the skills of formal religious personnel. They are not proficient in either performing the "flaming mouth" ritual or conducting repentance ceremonies. A large portion of them are also illiterate.
 
-　　道佛宗教人员的低素质，给了临高的民间宗教以极大的活动空间，同样，也给了耶稣会以极大的发展前途。
+The low quality of the Taoist and Buddhist clergy has given great room for maneuver to Lingao's folk religions, and similarly, it has given the Society of Jesus a great future for development.
 
-　　拜会了临高修会和那位吴院长之后，我深信，临高教会如果毫无制衡地发展下去，最终会在穿越者政权取得国教的地位。
+After meeting with the Lingao Mission and that Director Wu, I am deeply convinced that if the Lingao Church is allowed to develop without any checks and balances, it will eventually achieve the status of a state religion in the transmigrators' regime.
 
-　　然而，我们大部分穿越者似乎没有意识到一个国教的存在有什么意义。是的，目前我们穿越集团是一批受无神论影响的精英，受宗教办公室制约的临高教会在任何一个层面都无法与穿越集团抗衡。但是，在这个尚未普及义务教育和唯物主义思想的17世纪，教会毫无疑问将比我们的教育有着更广泛的影响。
+However, most of us transmigrators do not seem to realize the significance of a state religion. Yes, our current transmigration group is an elite influenced by atheism, and the Lingao Church, constrained by the Religious Affairs Office, cannot compete with the transmigration group on any level. But, in this 17th century where compulsory education and materialist thought have not yet been popularized, the church will undoubtedly have a broader influence than our education system.
 
-　　我们穿越集团可以不受它那些鬼话的蛊惑，然而，我们的后人，我们的臣民呢？显然我们不会用马列主义唯物主义或者任何一种工业化社会的理论去影响他们中的大多数人。事实上以女仆革命里占据绝大多数的酱油党人的表现来看，他们也不会关注这个问题。
+Our transmigration group may not be swayed by their nonsense, but what about our descendants and our subjects? Obviously, we will not use Marxism-Leninism, materialism, or any other theory of an industrialized society to influence the majority of them. In fact, judging by the performance of the vast majority of the "soy sauce party" (passive bystanders) in the "Maid Revolution," they will not pay attention to this issue either.
 
-　　可以想见，在几十年后，临高教会将成为影响社会的一支举足轻重的力量，而在穿越者们老去之后，它的影响力还将继续扩大，甚至将反过头来反噬穿越者政权本身。
+It is conceivable that in a few decades, the Lingao Church will become a pivotal force influencing society. And after the transmigrators have grown old, its influence will continue to expand, and may even turn back to bite the transmigrator regime itself.
 
-　　我想，我们需要一个临高教会的制衡者来平衡这个我们亲手造就的怪物的一家独大，或许，这正是上天给予我的使命吧。
+I think we need a counterweight to the Lingao Church to balance the dominance of this monster we have created with our own hands. Perhaps, this is the mission that heaven has given me.
 
-　　**************************************************
+**************************************************
 
-　　近代以来，我们看到的全真、正一各教派，都是神仙道教的标准模式。但是我们如果上溯到最古老的天师道和太平道，注意一下《太平经》和《想尔注》的话，会发现，原始道教对各种追求成仙的方术是不怎么感冒的。
+The Quanzhen and Zhengyi sects that we have seen in modern times are the standard models of divine-immortal Taoism. But if we trace back to the oldest Way of the Celestial Masters and the Way of Great Peace, and pay attention to the "Taiping Jing" and the "Xiang'er Zhu," we will find that primitive Taoism was not very interested in the various arts of pursuing immortality.
 
-　　比如《想尔》评价当时的方士吐纳导引存神观想为“伪术”，称那些祭祀鬼神的道派为“伪道”，而《想尔注》提倡的是守戒以近道。然而天师道很快和巴蜀的鬼道合流，加入了大量符咒法术之类它原本反对的内容。这样一种“扛着红旗反红旗”的宗教演变，在中世纪的各个教派里都有类似情况。
+For example, the "Xiang'er" commentary evaluated the Daoist techniques of breathing, gymnastics, and meditation as "false arts," and called those Taoist sects that worshiped ghosts and gods "false ways." The "Xiang'er Zhu" advocated observing the precepts to get closer to the Tao. However, the Way of the Celestial Masters soon merged with the ghost cults of Bashu, incorporating a large amount of content it originally opposed, such as talismans and magic spells. This kind of religious evolution, "waving a red flag to oppose the red flag," has similar situations in various medieval sects.
 
-　　比如，基督教受罗马异教信仰的影响，开始吸收欧洲各民族的神灵为圣徒；南亚和中亚的伊斯兰教保留了萨满教的精灵崇拜；印度佛教传入中原之后结合道家思想诞生了呵佛骂祖的禅宗。
+For example, Christianity, influenced by Roman pagan beliefs, began to absorb the gods of various European nations as saints; Islam in South and Central Asia retained the spirit worship of Shamanism; Indian Buddhism, after being introduced to the Central Plains, combined with Taoist thought to give birth to Zen Buddhism, which cursed the Buddha and scolded the patriarchs.
 
-　　即使我们宗教办的白司铎与吴院长，他们传播基督教的时候，也不得不迁就大明的习俗。
+Even our Religious Affairs Office's Father Bai and Director Wu have to accommodate the customs of the Ming Dynasty when they spread Christianity.
 
-　　教义被异质文明所异化，这是传教工作中必然出现的问题。虽然，我们临高众拥有远超这个时代的知识与历史经验，可惜这个问题依旧无法避免。但是，临高的思想注定要取代旧思想，临高的宗教注定要取代旧宗教，无论是罗马公教、正教还是佛教与传统道教，都必然被临高的宗教所取代，这是一场伟大的意识形态战争，是容不得温情脉脉和谦恭礼让的。
+The heterogenization of doctrine by a different civilization is an inevitable problem in missionary work. Although we, the Lingao multitude, possess knowledge and historical experience far beyond this era, this problem is still unavoidable. However, Lingao's ideology is destined to replace the old ideology, and Lingao's religion is destined to replace the old religions. Whether it is Roman Catholicism, Orthodoxy, Buddhism, or traditional Taoism, they will all inevitably be replaced by the religion of Lingao. This is a great ideological war, where there is no room for tender feelings, modesty, or courtesy.
 
-　　纵观历史，一般的行政手段无法消灭旧宗教，只有当一个民族彻底地皈依了新宗教之后，才会完全与旧宗教决裂。也即是说，唯有宗教可以消灭宗教。
+Throughout history, general administrative measures cannot eliminate old religions. Only when a nation completely converts to a new religion will it completely break with the old one. That is to say, only religion can eliminate religion.
 
-　　我们道教理事会的任务，不是完全的消灭旧教派，而是通过走进信众、团结信众、发动信众，从而将旧教派的一切观主、寺主、道官、僧官彻底孤立，将旧的宗教模式、宗教制度完全打破，建立服从我们穿越众的新教派……
+The task of our Taoist Council is not to completely eliminate the old sects, but to walk among the believers, unite them, and mobilize them, so as to completely isolate all the old abbots, temple masters, Taoist officials, and monk officials. We will completely break the old religious models and systems and establish a new sect that obeys us, the transmigrators...
 
-　　摘自张应宸理事长《在宗教办新年研讨会上的讲话摘要》
+-- Excerpt from Chairman Zhang Yingchen's "Abstract of the Speech at the New Year's Seminar of the Religious Affairs Office"
 
-　　***********************************************
+***********************************************
 
-　　利玛窦神父一直坚持认为这片古老的土地上有着我主救恩的遗迹。遗憾的是，在曾德昭神父参与了发掘并翻译一千年前唐帝国皇帝为我主耶稣所树立的神圣教会碑刻（即大秦景教中国流行碑）的重要时候，利玛窦神父已经来不及分享我主耶稣借着分袂兄弟之手，遗留在这个帝国的圣迹了。
+Father Matteo Ricci always believed that this ancient land held traces of our Lord's salvation. It is a pity that by the time Father Álvaro Semedo participated in the excavation and translation of the sacred church stele erected for our Lord Jesus by the emperor of the Tang Empire a thousand years ago (that is, the Xi'an Stele), Father Ricci was no longer able to share in the holy miracle that our Lord Jesus had left in this empire through the hands of his separated brothers.
 
-　　但是，我相信无所不能的天主早已以自己的方式，给予了中国古代贤者以启示。只是在印度地区的毕达哥拉斯的信徒（耶稣会一度认为印度佛教及印度教是希腊毕达哥拉斯密教的支裔），以他们的谬论和异端有毒的见解，污染了主的福音。
+However, I believe that the almighty God has already given revelations to the ancient Chinese sages in His own way. It is just that the followers of Pythagoras in the Indian region (the Jesuits once believed that Indian Buddhism and Hinduism were offshoots of the Greek Pythagorean esoteric school), with their fallacies and poisonous heretical views, have polluted the Lord's gospel.
 
-　　这使得儒教的哲学家们逐渐失去了先辈们的崇高理想，而毕达哥拉斯的见解对于受启示的另一派哲学家的损害，几乎是不可挽回的。使得这些原本应当居住于至福的玫瑰园中的学者，堕落成了如同诺斯替一样的炼金术士和偶像崇拜者。
+This has caused the Confucian philosophers to gradually lose the lofty ideals of their ancestors, and the damage of Pythagorean views to the other school of inspired philosophers is almost irreparable. It has caused these scholars, who should have resided in the blessed rose garden, to degenerate into Gnostic-like alchemists and idolaters.
 
-　　临高的博学元老们在提到旧帝国的现状时，通常认为北方的鞑x靼人是最大的文明与信仰之敌。他们提到匈奴王阿提拉，还有威尼斯人马可波罗所效力的鞑靼王朝，以及对于古老伟大的帝国文明遭到游牧民族破坏的痛心。
+When the learned elders of Lingao mention the current state of the old empire, they usually consider the Tartars in the north to be the greatest enemy of civilization and faith. They mention Attila the Hun, the Tartar dynasty that the Venetian Marco Polo served, and their grief over the destruction of the ancient and great imperial civilization by the nomadic peoples.
 
-　　作为一批流亡于海外的前王朝贵族后裔而言，“元”这个王朝是不可宽恕的，但是在我，一个异邦教士的眼里。鞑靼人最不可饶恕的罪行，是他们以毕达哥拉斯的印度信徒的有害思想，毒化了原本属于中国人的两条救恩之路，使得儒家和道家那些受到恩召和启示的睿智经典，最终变成了今天哲学家官员“曼达林”这个团体的僵化守则和只知道炼金术和符咒之类有害灵魂的异端学说的道士们手中摆弄的东西。
+As a group of descendants of exiled nobles from a former dynasty, the "Yuan" dynasty is unforgivable. But in my eyes, a foreign priest, the Tartars' most unforgivable crime is that they used the harmful ideas of the Indian followers of Pythagoras to poison the two paths of salvation that originally belonged to the Chinese people. This turned the wise classics of Confucianism and Taoism, which had received grace and revelation, into the rigid rules of the "Mandarin" group of philosopher-officials and the playthings of Taoist priests who only knew of alchemy and other soul-harming heresies.
 
-　　但是，我主基督的救恩使得他们最优秀的领袖在野蛮异教徒几乎毁灭了这个国家最光明最荣耀的一面的时候，像出埃及记里的那位先知一样，带领着最优秀的人找到了一个新的耶路撒冷。在这里，他们保留了我主的救恩，还有他们最光荣的道德、传统、知识和尊严。
+However, the salvation of our Lord Christ enabled their best leaders, when the barbarian heretics had almost destroyed the brightest and most glorious side of this country, to lead the best people to find a new Jerusalem, just like the prophet in Exodus. Here, they have preserved our Lord's salvation, as well as their most glorious morals, traditions, knowledge, and dignity.
 
-　　他们也保留了他们自己的宗教，然而，这宗教是没有经过印度的有害学说所毒化的。它其中有无数合理的因素表明，它曾经包含了主耶稣的救恩之路，也是最能适应耶稣基督的种子生长并开花结果的沃土。
+They have also preserved their own religion. However, this religion has not been poisoned by the harmful doctrines of India. It contains countless reasonable elements that show that it once contained the path of salvation of the Lord Jesus, and it is also the most fertile soil for the seeds of Jesus Christ to grow, blossom, and bear fruit.
 
+**************************************************
 
-　　**************************************************
+Thirty years after the publication of this monumental work, the famous "Rites Controversy" broke out between the Empire and the Italian Church. The ignorant and conservative feudal leader, the pseudo-Pope Clement XI, went against the tide of history and brazenly declared "The Great Empire Chronicle" a forbidden book, placing it on the European Index of Forbidden Books. The historically significant movement of "Eastern learning spreading to the West" also fell into decline due to his series of reactionary measures. This consequently led to Europe gradually falling behind the great tide of historical development.
 
-　　在这部鸿篇巨著出版三十年后，帝国与意大利教会就爆发了著名的“礼仪之争”，愚昧保守的封建头目伪教宗克雷芒十一世逆历史潮流而动，悍然宣布《大帝国记》为禁书，并列入欧罗巴洲禁书目录，具有历史性意义的东学西渐运动也因为他的一系列反动举措而陷入颓势。并因此导致了欧洲逐渐落于历史发展的大潮之后。
+-- Introduction to the "Great Empire Chronicle" section of the "Index of Forbidden Books of the Pseudo-Roman Curia"
 
-　　《伪罗马教廷禁书目录之大帝国记篇导言》
+****************************************************
 
-　　****************************************************
+**Zhang Yingchen's letter to He Ying before his departure**
 
-　　张应宸临行前致使何影的信
+When He Ying received Zhang Yingchen's letter, the tall "Mongolian doctor" was already on a boat to the mining area.
 
-　　何影收到张应宸的信的时候，这个高个子的蒙古大夫已经乘上了去矿区的船。
+Holding this document, which was less a personal letter and more a work plan, He Ying had to admire the courage and drive of this "god-stick" (charlatan).
 
-　　拿着这份与其说是私信，不如说是工作计划书的东西，何影不得不钦佩这个神棍的勇气与行动力。
+He sat down, unfolded the letter, and slowly read the farewell words of Lingao's first Libationer and Chairman of the Taoist Association.
 
-　　他坐下来，展开信纸，慢慢地读着临高第一任祭酒兼道协理事长的临别赠言。
+"...The collision between heterogeneous civilizations often results in the advanced eliminating the backward, the civilized eliminating the barbaric. So in this era, the Jesuits easily eliminated the Mayan priests in South America. Three hundred years earlier, Islam and Tibetan Buddhism easily converted two branches of the Mongols. But collision inevitably brings fusion, and for religion, being permeated by the old traditions of new believers is also difficult to avoid.
 
-　　“……异质文明之间的碰撞，其结果往往是先进的消灭落后的，文明的消灭野蛮的。所以这个时代，耶稣会轻易地消灭了南美的玛雅祭司，往上推溯三百年，伊斯兰教与藏传佛教轻而易举地让两支蒙古人接受皈依。但是，碰撞必然带来交融，对于宗教而言，被新信徒的旧传统所浸染也是难以避免的。
+"Comrade Wu Mangshi seems to want to conduct a social experiment in Lingao to change customs, just as the Jesuits in Macau who built chapels to the Virgin Mary that look like Guanyin temples are trying to do. This kind of thing has been tried by Islamic leaders in Central and Southeast Asia, and by Franciscan, Dominican, and Jesuit monks in South America. But, without exception, they have failed shamefully.
 
-　　“吴茫石同志似乎想要在临高进行移风易俗的社会实验，就像澳门的那些修建了送子观音庙般的圣母堂的耶稣会士正在尝试的那样。这种事情，中亚与东南亚地区的伊斯兰教长，南美的耶稣会、多明我会、方济各会的修士都尝试过。但是，毫无例外地可耻地失败了。
+"The herdsmen of Central Asia still trust their shamans, the Muslims of the Philippines still worship sacred trees, and the goddesses of the Maya and Inca continue to occupy the center of South American churches in the guise of Our Lady of Guadalupe. It is foreseeable that in the future work of the Religious Affairs Office, resisting the erosion of the old culture will be a long-term and arduous task.
 
-　　“中亚的牧民依然信任萨满巫师，菲律宾的穆斯林依旧崇拜圣树，玛雅与印加的女神继续以瓜达卢佩圣母的模样占据了南美教堂的中心，可以预想，在宗教办的日后工作中，抵御旧文化的侵蚀将成为长期的，艰苦的任务。
+"Therefore, conversion, changing beliefs, and changing customs can only be preliminary work. As Matteo Ricci said, 'This is just cutting away some branches in a thorny wasteland.'
 
-　　“所以，改宗、改信、移风易俗，只能是初步的工作，如同利玛窦所言‘这只是在荆棘丛生的荒地里砍去了一些枝蔓’。
+"Only by reshaping the soil on which the old society and old culture survive can we truly achieve our goal.
 
-　　“只有重塑了旧社会以及旧文化所生存的土壤，才能够真正达到我们的目的。
+"The ultimate goal of transforming beliefs is to transform civilization, that is, to transform the medieval agricultural civilization into a modern industrial civilization. I hope that I and my successors will always remember this point, and not foolishly fall into some kind of dogmatic, fetishistic self-seclusion and regression.
 
-　　“改造信仰的最终目的是改造文明，亦即将中世纪的农耕文明转入现代的工业文明，我希望我及我的继任者能够始终记得这一点，而不是愚蠢地陷入某种教条主义的拜物教式的自我封闭和倒退中去。
+"The medieval, obscurantist religious opium is beneficial to us in the short term, but in the long run, we must break away from the Catholic style and change the short-term investment of 'pulling in sheep's heads' into a long-term, continuous investment.
 
-　　“中世纪的愚民式宗教鸦片短期之内对我们是有利的，但是长远来看，我们必须摆脱天主教式的作风，把拉羊头式的短线投入转变成长期的持续的投入。
+"The church should bear the obligation of teaching. In addition to ideological education instilled through religious forms, basic education is the top priority of our work. The boring debates between late Ming monks, priests, and Confucian scholars over the 'translation of God's name,' 'heaven and hell,' and the 'similarities and differences between Taiyi, Hundun, Taiji, Li, and God' were nothing more than a set of European medieval philosophy and a set of Asian medieval philosophy competing for orthodoxy and the right to speak.
 
-　　“教会应当负担起教学义务，借由宗教形式灌输的意识形态教育之外，基础教育才是我们工作的重中之重。明末僧侣教士和儒士之间无聊的‘天主译名之争’、‘地狱天堂之争’、‘太一混沌太极与理与天主的异同之争’，无非是一套欧洲的中世纪哲学与一套亚洲的中世纪哲学在争夺正统性和话语权罢了。
+"Our job is not to introduce a new set of opium for the convenience of ruling, but to act as a catalyst for the transformation of the old society into a new one. We are not trying to create a new wine in an old bottle, using new gods to replace old gods, but to use the hand of a new god to gradually eat away at the foundation of the existence of divine right. The secularization and simplification of religion is a manifestation of social progress in the 17th century. We must guide this new trend, not add a new set of red tape on the basis of overthrowing the old rituals, and certainly not turn nature fetishism into machine fetishism, which is boring and meaningless.
 
-　　“我们的工作不是引入一套新的鸦片以便于统治，而是作为旧社会转化为新社会的催化剂，我们也不是要创立一套新瓶旧酒的货色，用新神去取代旧神，而是以新神的手去逐步蚕食神权存在的根基。宗教世俗化简易化是17世纪社会进步的表现，我们要引导这个新潮流，而不是在推翻了旧礼仪的基础上再增加一套新的繁文缛节，更不是将自然拜物教变成机械拜物教这样无聊而不知所谓的东西。
+"In my lifetime, I am afraid I will have to reconcile with the beliefs of the old world. Various 17th-century cults may be born in the Lingao monastery, and a radical, restorationist 'True Lord's Advent' faction or a Taoist version of the Golden Dawn may appear in the Taoist Council. But we must do a good job in education. Only a thoroughly secularized civilized world can cut off the ghost of the Middle Ages from its roots.
 
-　　“在我有生之年，恐怕不得不和旧世界的信仰有所调和，临高修院之中也许会诞生17世纪的各种邪教，道教理事会里恐怕会出现激进复古的真君降临派或者道教版金色曙光会。但是务必要将教育工作抓好，只有一个彻底世俗化的文明世界，才能从根子上斩断中世纪的幽灵。
+"At this moment, let's not be like the official of Jiangzhou, whose blue shirt was soaked with tears, which would be too unsightly. Let us emulate the sage of Wenchuan and shout, 'Pour me a bowl of wine for the journey!' and embark on the adventure that belongs to me and to you all.
 
-　　此刻莫学江州司马，青衫湿透也未免太难看了点，就让我们效法那位汶川的圣人，高呼一声‘为我斟一碗践行的酒吧’，踏上属于我和诸位的冒险之途。
-
-　　祝我顺风吧，老朋友。”
+"Wish me a fair wind, my old friend."
