--- a/_posts/2009-8-28-0-00900.md
+++ b/_posts/2009-8-28-0-00900.md
@@ -1,61 +1,59 @@
 ---
 layout: post
-title: 平行线上的奇迹：伟大的澳宋帝国铁道（更：帝国一年路基线路）
+title: "Miracle on Parallel Lines: The Great Aus-Song Imperial Railway (Update: Imperial Year One Rail Infrastructure)"
 category: 0
 path: 2009-8-28-0-00900.md
 tag: [normal]
 ---
 
-　　[itany]
+[itany]
 
-　　你能想像没有铁路的生活么？
+Can you imagine life without railways?
 
-　　“如果没有京畿城际，我想，没人能舒适的靠在坐席里，品一杯咖啡，看看杂志，玩玩桔子公司最新的移动电话，两个小时从松江府去到扬州府…… 我们不得不自己开车，劳心劳力的走过快速驿道……我是指，如果还能叫做‘快速驿道’的话——按照帝国的汽车保有率，如果大家都开车走驿道的话，必然会堵成一团，能慢慢爬着前进就不错了。即便是不堵车，也需要6个小时，如果堵车的话，谁知道是多少时间呢？也许是10个小时，也许是12个小时？我想，一定能看到蜗牛慢慢的超过我的汽车…… 我想，我一定会暴怒，狠狠的把他碾碎…… 呵呵” ——松江府市民何申林先生
+"If it weren't for the Capital Intercity Railway, I don't think anyone could comfortably lean back in their seat, sip a cup of coffee, read a magazine, play with the latest mobile phone from the Orange Company, and get from Songjiang Prefecture to Yangzhou Prefecture in two hours... We would have to drive ourselves, laboriously taking the express post road... I mean, if you can still call it an 'express post road'—given the Empire's car ownership rate, if everyone drove on the post road, it would inevitably become a traffic jam. It would be good enough to just crawl forward slowly. Even without traffic, it would take 6 hours. If there is traffic, who knows how long it would take? Maybe 10 hours, maybe 12 hours? I think I would definitely see a snail slowly overtaking my car... I think I would be furious and crush it mercilessly... Hehe" — Mr. He Shenlin, a citizen of Songjiang Prefecture.
 
-　　“如果没有东海高速线，我从燕平府到松江府面试，可就折腾了。是的，还可以帝国北方航空或者南方航空的客运飞机——事实上我之前也乘坐过，但是小东庄机场你懂的，飞机在栈桥多停了一个小时，进跑道之前转了三大圈，然后又排了一个多小时的队，终于起飞了，在路上颠得就跟炖肉时候锅里的花椒似的，乘务员给我倒水的时候水都洒在自己衣襟上了——肌肉确实美型的说，不过高速铁路上的乘务小哥也超可爱啊，就算打平了…… 啊，不好意思，回到刚才的话，好不容易到了松江府，结果天气又不行了，飞机掉头又回去了…… 就因为飞机票价超低才坐的，结果在飞机上吃了三个高价盒饭，喝了5筒饮料，最后算下来比做高速铁路还贵……"——燕平大学硕士研究生沈临贺小姐
+"If it weren't for the East Sea High-Speed Line, my interview trip from Yanping Prefecture to Songjiang Prefecture would have been a real ordeal. Yes, I could have taken a passenger plane from Imperial Northern Airlines or Southern Airlines—in fact, I have before. But you know Xiaodongzhuang Airport. The plane was parked at the jet bridge for an extra hour, circled three times before entering the runway, and then queued for another hour. It finally took off, and the ride was as bumpy as peppercorns in a pot of stew. When the flight attendant poured me water, it spilled all over his shirt—his muscles were indeed beautiful, but the stewards on the high-speed rail are also super cute, so it's a tie... Ah, sorry, back to what I was saying. After finally arriving in Songjiang Prefecture, the weather turned bad, and the plane turned around and went back... I only took the plane because the ticket was super cheap, but I ended up eating three expensive boxed meals and drinking five cartons of drinks on the plane. In the end, it was more expensive than taking the high-speed rail..." — Ms. Shen Linhe, a master's student at Yanping University.
 
-　　”如果没有帝国铁道的畅行悠游，我们这些老干部想要出门游玩可是不容易。您说我们给元老院和帝国人民服务了一辈子，总想看看帝国山河的壮丽，海疆的秀美不是？但一把老骨头，不比年轻人，是经不起旅途劳顿了。不过好在帝国铁道开了悠游专列，您瞧这卧铺，比五星级客栈可能比不上，比三星级客栈那是没问题啊。我这到晚上就睡一觉，腰不酸，腿不疼，下了车一气儿走半天，不费劲儿。真的太好了。这车上餐厅也地道，手抓羊肉、大盘鸡、拌面，可不比兵团里边招待所的差。还有观景车，一杯红茶，坐在观景窗前，田野山川尽收眼底，也是无比的享受啊……”——轮台生产建设兵团退休干部布热·林申勒旧布热勒河卞西提先生
+"Without the Imperial Railway's Carefree Tour, it would be difficult for us old cadres to travel. You know, we've served the Senate and the people of the Empire our whole lives, and we always want to see the magnificence of the Empire's mountains and rivers, the beauty of its sea borders, right? But these old bones are not like young people's; they can't stand the fatigue of travel. But fortunately, the Imperial Railway has opened the Carefree Tour special train. Look at this sleeper berth, it might not compare to a five-star inn, but it's definitely better than a three-star inn. I just sleep through the night, no backache, no leg pain. I get off the train and can walk for half a day without getting tired. It's really great. The restaurant on this train is also authentic. The hand-pulled mutton, the big plate chicken, the mixed noodles, they're no worse than the guesthouses in the corps. There's also an observation car. A cup of black tea, sitting in front of the observation window, the fields, mountains, and rivers are all in view. It's an incomparable enjoyment..." — Mr. Bure Linshenlejiu Burelehe Bianxiti, a retired cadre from the Luntai Production and Construction Corps.
 
-　　“如果没有帝国铁道的电煤运输，我们一定会完蛋的。支撑帝国电力系统的除了星罗棋布的发电所和超高压互联电网，铁道的电煤运输也是功不可没。尽管我不是铁道系统的，但是，必须公允的说，铁路的电煤甚至比互联电网更重要——煤炭运输比长途跨区输电损耗要小些，而且对保证电网的健壮性有至关重要的作用。帝国的煤炭主要分布在黄河以北的地区，而且往往远离人口稠密的经济中心，必须通过铁路运输，才能够满足需求。我去出差的时候，尤其是去中央通道（京广深港）、东海通道（沈大+津沈+京沪+沿海+泛亚铁路）、西海通道（美加太平洋铁路）、中陆通道（陇海+兰新+中亚铁路）等超级干线，都喜欢站在天桥上看脚下10万吨组合列车隆隆的开过…… 我要为每年运输的30亿吨电煤向铁道的同仁致敬！我们电力是站在你们铁道巨人的肩膀上才能有现在的成绩的！”——帝国能源部电力局局长贺琳谌先生
+"If it weren't for the Imperial Railway's coal transport for power generation, we would definitely be finished. What supports the Empire's power system, besides the scattered power plants and the ultra-high voltage interconnected grid, is the railway's coal transport, which has made a great contribution. Although I'm not from the railway system, I must say in all fairness that the railway's coal transport is even more important than the interconnected grid—transporting coal is less lossy than long-distance cross-regional power transmission, and it plays a vital role in ensuring the robustness of the power grid. The Empire's coal is mainly distributed in the areas north of the Yellow River, and is often far from the densely populated economic centers. It must be transported by rail to meet the demand. When I go on business trips, especially on super trunk lines like the Central Corridor (Beijing-Guangzhou-Shenzhen-Hong Kong), the East Sea Corridor (Shenyang-Dalian + Tianjin-Shenyang + Beijing-Shanghai + Coastal + Pan-Asian Railway), the West Sea Corridor (US-Canada Pacific Railway), and the Central Land Corridor (Longhai + Lanxin + Central Asian Railway), I love to stand on a footbridge and watch the 100,000-ton unit trains rumbling past below... I want to pay tribute to my colleagues in the railway for the 3 billion tons of coal transported annually for power generation! We in the power industry stand on the shoulders of you railway giants to achieve our current success!" — Mr. He Linchen, Director of the Power Bureau, Imperial Ministry of Energy.
 
-　　“如果没有帝国铁道的保温车快运，估计餐桌上的美食要少一半呢。红油火锅烫肥牛，金黄酥脆烤羊腿，你喜欢，我也喜欢，民以食为天么。我们帝国合作社呢，现在最主要的，就是满足人民日益增长的吃的需要。但是，帝国最好的牛羊在北方一望无际的草原，让南方的广大人民吃上，可不是容易的事儿。现在我们帝国合作社在北方牧区大量收购牛羊，然后统一宰杀分割，冷冻排酸，对，这就是我们最畅销的冷鲜肉，然后，帝国铁道的快速机械保温车直接开进冷库装车，3日内可以到帝国任何主要城市，同样直接进冷库卸车——这就是我们为之骄傲的无缝冷链，百分百新鲜，锁住营养。去年年前黄金周，仅仅在广州地区，我们的销售量就达到每天接近一万吨。同样，我们让西安甚至轮台以西的地区，吃到了新线的金枪鱼和生蚝……另一方面，我们也在冬季把南方的新鲜蔬菜坐着机械保温车运输到北方。在燕平府、沈阳府每天都有数万吨蔬菜调入，极大保证了市场供应…… 我想，这一方面是我们合作社上上下下的努力，另一方面，也必须真诚的感谢帝国铁道填饱了我们的胃口呢”——帝国合作社物流总监申鹤临女士
+"If it weren't for the Imperial Railway's refrigerated express transport, I estimate that half of the delicacies on our dining tables would be gone. Hot pot with fatty beef, golden and crispy roasted lamb leg—you like it, I like it, food is the first necessity of the people. Our Imperial Cooperative, our main task now is to meet the people's growing need for food. However, the Empire's best cattle and sheep are on the vast grasslands of the north. Getting them to the tables of the broad masses of people in the south is no easy task. Now, our Imperial Cooperative purchases large quantities of cattle and sheep in the northern pastoral areas, then slaughters and cuts them uniformly, freezes them, and lets them age—yes, this is our best-selling chilled fresh meat. Then, the Imperial Railway's refrigerated mechanical reefer cars drive directly into the cold storage for loading, and can reach any major city in the Empire within 3 days, and are unloaded directly into cold storage—this is our proud seamless cold chain, 100% fresh, locking in the nutrients. During the Golden Week before last year's New Year, just in the Guangzhou area, our sales volume reached nearly 10,000 tons per day. Similarly, we let the areas west of Xi'an and even Luntai eat fresh tuna and oysters... On the other hand, we also transport fresh vegetables from the south to the north in refrigerated mechanical reefer cars in winter. In Yanping Prefecture and Shenyang Prefecture, tens of thousands of tons of vegetables are transferred in every day, greatly ensuring market supply... I think, on the one hand, this is the effort of our cooperative from top to bottom. On the other hand, we must also sincerely thank the Imperial Railway for filling our stomachs." — Ms. Shen Helin, Logistics Director of the Imperial Cooperative.
 
-　　“如果没有帝国铁道燕平电铁，还有几个能正常生活的？我家里边有老人，当初买房子就买在环境比较好的青龙桥——当然，那边房子也便宜，但是，后来我换了工作，去了集电社（世界最大的微处理器制造商）燕平研发中心，工作地点很多人都知道，在三里屯先进科技园，是个好地方，但是假如没有电铁上班就麻烦了，要开车走官道，单单想想那可怕的三环官道…… 但是我坐电铁延武线（延庆-武清），再转内藏线（沿三环），不到一个小时就到了，车上还不算挤，而且有免费的无线局域网路接入，玩玩桔子手机是最方便的。要去逛商店更是很容易，去王府井大世界，或者国贸大世界之类，都在长安地下线上。我也去过不列颠的伦敦等，也坐过他们的电铁，那坑爹的窄车厢，小编组，走死人的换乘……我澳宋和他相比，不知道要好多少倍。我要赞颂帝国铁道的先驱和一辈辈的建设者，你们建设的电铁路网，正泽被后人，而我们也不会忘记你们的”——集电社高级工程师蔺合堔先生
+"If it weren't for the Imperial Railway's Yanping Metro, how many people could live a normal life? I have elderly people at home, so when I bought a house, I bought it in Qinglongqiao, where the environment is better—of course, the houses there are also cheaper. But later I changed jobs and went to the Jidian Society (the world's largest microprocessor manufacturer) Yanping R&D Center. Many people know the work location, it's in the Sanlitun Advanced Science and Technology Park, a good place. But if there were no metro, commuting would be troublesome. I would have to drive on the official road, and just thinking about that terrible Third Ring official road... But I take the Yanwu Line (Yanqing-Wuqing) of the metro, then transfer to the Neizang Line (along the Third Ring), and I get there in less than an hour. The train is not too crowded, and there is free wireless LAN access, which is most convenient for playing with my Orange mobile phone. It's also very easy to go shopping. Places like Wangfujing Great World or Guomao Great World are all on the Chang'an Underground Line. I have also been to London in Britain and have taken their metro. Those pitifully narrow cars, small trainsets, and transfers that make you walk to death... Our Aus-Song is countless times better than them. I want to praise the pioneers of the Imperial Railway and the generations of builders. The metro network you have built is benefiting future generations, and we will not forget you." — Mr. Lin Heshen, Senior Engineer at the Jidian Society.
 
-　　正如以上所言，各行各业的生产，天南海北的人民，乃至帝国本身，离不开铁道。而帝国铁道，也用500多亿人次的旅客发送量，10万亿吨公里的货物周转量，交上了一副满意的答卷。这也就是说：帝国铁道承担了帝国境内50%的旅客运输和76%的货物运输。而在全球范围内的铁路总运量，帝国铁道的客货运量均占到80%以上。帝国铁道，是帝国的骄傲，也无愧于伟大。
+As stated above, the production of all walks of life, the people from all corners of the country, and even the Empire itself, are inseparable from the railway. And the Imperial Railway, with a passenger volume of more than 50 billion person-times and a freight turnover of 10 trillion ton-kilometers, has handed in a satisfactory answer sheet. This means that the Imperial Railway undertakes 50% of the passenger transport and 76% of the freight transport within the Empire. And on a global scale, the Imperial Railway's passenger and freight volume both account for more than 80% of the total railway transport volume. The Imperial Railway is the pride of the Empire, and is worthy of being called great.
 
-　　但是，正如帝国第一代领导集体所说：伟大来自于平凡加不懈努力。在临高的圣地博物馆里，还存留着澳宋铁路最早的起点。可能一般人根本不会想到，当今令环球各国艳羡的时速400宽体双通道动车组和牵引10万吨组合列车的超级拖曳机车，竟然有一个共同的祖先——由蒸汽锅驼机改装成的小车头，吃力的拉着30吨货物，摇摇晃晃的以不到5公里的时速走在熟铁加原木铺设的轨道上……
+However, as the first generation of the Empire's leadership said: greatness comes from the ordinary plus unremitting efforts. In the Holy Land Museum in Lingao, the earliest starting point of the Aus-Song Railway is still preserved. Perhaps ordinary people would never have thought that today's 400 km/h wide-body double-aisle EMU that is the envy of countries around the world and the super-towing locomotive that pulls 100,000-ton unit trains would have a common ancestor—a small locomotive converted from a steam dray, struggling to pull 30 tons of cargo, swaying at a speed of less than 5 kilometers per hour on a track laid with wrought iron and logs...
 
-　　下面请允许我大概回顾一下帝国铁道发展的伟大历程……
+Now please allow me to briefly review the great course of the development of the Imperial Railway...
 
-　　
+**Imperial Year One Railway Vehicles**
 
-　　帝国一年的铁路车辆
+"The railway comes from industry and serves industry." When one mentions the railway, one naturally thinks of the Bopu Industrial Zone and the Bairencheng Industrial Zone in the Holy Land Museum. In fact, not long after the first generation of Elders descended on the holy ship, they formulated the "First Five-Year Plan" and decided to lay a simple industrial and mining railway system in the industrial zone to meet the needs of material entry and exit and equipment installation. Some Elders even proposed to build a comprehensive urban rail transit system for both passengers and freight, covering the entire Bairencheng, major farms, water transport terminals, and even the various workshops, office buildings, and warehouses in the Wenlan River area, based on the factory and mine railways. However, it was discovered during the later construction that this was an impossible goal under the constraints of limited resources—in fact, the ambitious first-generation Elders often had grand ideas, but were forced to be down-to-earth due to the national conditions. This has become a common point of complaint in the memoirs of the first-generation Elders.
 
-　　“铁路来自于工业，服务于工业”。提到铁路，很自然的就想像到圣地博物馆中的博铺工业区和百仞城工业区。事实上帝国的初代元老们乘坐圣船降临后不久，就制订了“第一个五年计划”，决定在工业区铺设简易工矿铁路系统，满足物资进出和设备安装的需要。甚至还有元老提出，以厂矿铁路为基础，建立一个涵盖整个百仞城、主要农场、水运码头，乃至文澜河地区各个车间、办公楼、仓库的一个客货兼顾的城市轨道交通系统。然而后来的建设当中发现，在有限的资源限定下，这是一个不可能实现的目标——事实上，壮志凌云的初代元老们经常会有伟大的设想，然而受制于国情又不得不脚踏实地，这一点在初代元老的回忆录里边成为经常可见的吐槽点。
+The first batch of locomotives of the Imperial Railway—although some railway enthusiasts today are unwilling to include it in the sequence of locomotives, preferring to call it a simple self-propelled railcar, the mainstream view recognizes its status as a locomotive—was named "Popular No. 1." This batch of locomotives was scrapped after only two years of operation and was dismantled for other power sources. The exhibit we see today is a replica based on the memories of the Elders who participated in the project.
 
-　　帝国铁路的第一批机车——尽管目前有的铁路爱好者不愿意将它纳入机车的序列，而宁可叫他简易自行轨道车，但主流观点都是认可它作为机车的地位的——其名称为“流行一号”。这一批机车在运行两年之后就已经报废了，被拆解用于其他动力，目前我们看到的展品是根据参与该项目的元老的回忆所复刻的。
+In the early days of the Empire, the various industrial sectors had not yet been fully differentiated. The body of the Popular No. 1 locomotive was actually manufactured on the production line for assembling horse-drawn carriages in the vehicle workshop of the machinery factory. It was simply a Mozi No. 1 steam dray mounted on a general 2-axle flatcar. The so-called Mozi No. 1 steam dray was also the first batch of steam engines manufactured by the Imperial Machinery Factory. Its lower part was a Lancashire-type boiler, which belongs to the flue-type boiler. The main components were made of wrought iron, and the pipes were connected by riveting. It could only produce atmospheric pressure steam, and its thermal efficiency was very low. The steam engine structure was installed on top of the boiler. The cylinder was fixed on the cast iron base on the upper part of the boiler. The steam pushed the piston to move in the cylinder, and the reciprocating motion of the piston was converted into the rotation of the main shaft through a connecting rod and crankshaft structure. The main shaft was fixed on the bearing of the base—at that time, there were no rolling bearings, and even the white alloy friction surface on the sliding bearings was not available. It could only rely on liquid lubricating grease, so the wear was quite serious. Two eccentric wheels were set on the main shaft to drive the main slide valve and the expansion valve. The former controlled the entry and exit of steam, while the latter, under the control of the regulator, adjusted the intake volume to adapt to different load conditions. And how to transmit the power of the steam dray to the axle of the flatcar was a very difficult problem. In order not to change the body structure of the flatcar, it was finally decided to add a pulley to the front axle of the flatcar, dig a hole in the bottom plate of the flatcar, and the transmission belt passed through it to directly connect the main shaft of the steam dray with the pulley on the axle. This structure is very similar to the way power is introduced from the main shaft of a steam engine to the drive shaft of a machine tool through a belt in the Bairencheng factory. Today's railway locomotive science would absolutely not give such an incredible transmission method, but under the simple conditions at that time, to be able to think of this, one has to admire the wisdom of the Elders of that year.
 
-　　在帝国初创的日子里，工业各个部门还没有充分的分化，流行一号机车的车体实际上是在机械厂车辆车间总装马车的生产线上制造的，就是在一般的2轴平板车上边加装墨子一号锅驼机。而所谓墨子一号锅驼机，也是帝国机械厂制造的第一批蒸汽机，其下部是一个兰开夏型锅炉，属于烟道式锅炉，主要部件由熟铁制成，管道之间采用铆接，只能产生常压蒸汽，热效率很低。蒸汽机结构安装在锅炉上方，汽缸固定在锅炉上部的铸铁底座上，蒸汽在气缸内推动活塞运动，而通过连杆曲轴结构将活塞的往复运动转变为主轴的转动。主轴固定在底座的轴承上——当时还没有滚动轴承，甚至滑动轴承上的白合金摩擦面都没有，只能靠液体润滑油脂，因而磨损是比较严重的。在主轴上设置两个偏心轮，来带动主滑阀和膨胀阀，前者控制蒸汽的进出，而后者在调节器的控制下通过调整进气量来适应不同的负载条件。而如何将锅驼机的动力传到平车的车轴上是一个很困难的问题。为了不改动平车的车体结构，最后决定在平车的前轴上增加一个皮带轮，在平车的底板上挖一个洞，传动皮带由此通过将锅驼机的主轴与车轴上皮带轮直接相连。这个结构，和百仞城工厂里通过皮带将动力由蒸汽机的主轴引入到机床的驱动轴上是非常相似的。今天的铁路机车学里边绝对不会给出这样一个匪夷所思的传动方式的，但是在条件简陋的当时，能想到这一点，也不得不让人佩服当年元老的智慧。
+The manufacture of the 2-axle flatcar was also not as simple as replacing the body of a horse-drawn carriage with railway wheels. After calculation, directly using the chassis of the Red Flag horse-drawn carriage produced by the Empire at that time as the railway vehicle chassis, its tensile strength was found to be too low. Therefore, the thickness of the material of the longitudinal structure was doubled to increase the strength of the vehicle body. The vehicle also used a simple sliding bearing structure, and a guide frame structure was used to position the axle box. Since it was a 2-axle vehicle, no bogie was needed, so the guide frame was directly fixed to the underframe of the vehicle body. Originally, in the design, leaf springs should have been installed between the guide frame and the axle box as a suspension mechanism, but the tragic reality at that time was that leaf springs that could bear the load of railway vehicles could not be produced temporarily, so a pure rigid cast iron structure had to be used as a temporary substitute, to be replaced after the springs were produced. Many friends who are familiar with the history of the early years of the Empire may know that there was a school of thought at that time called "Multi-turret, Riveted, Steam-powered, Rigid"—multi-turret means installing multiple turrets on a combat unit, riveted means using riveting, steam means steam power, and rigid refers to this rigid suspension—some Elders were believers in this ideology, but even the most loyal supporters of "Multi-turret, Riveted, Steam-powered, Rigid" were unwilling to ride the railway vehicles of that time. Imagine the bone-numbing experience of a vehicle with a pure rigid suspension running on a track of average smoothness. It was also because the impact of the rigid suspension on the track was too great that the line, which was originally designed to carry an axle load of 10 tons, had to be temporarily limited to an axle load of 5 tons to ensure that rail break accidents did not occur frequently.
 
-　　而二轴平车的制造也并不是简单的马车车体换上铁路车轮那么简单。经过计算，直接将帝国当时生产的红旗马车的底架作为铁路车辆底架，其抗拉强度偏低，因而将纵向结构的材料厚度增加了一倍，来增加车体强度。车辆同样采用简陋的滑动轴承结构，采用导框结构对轴箱进行定位。由于是2轴车，并不需要转向架，因而导框直接固定在车体的底架上。本来，在设计的时候，导框和轴箱间应安装钢板弹簧作为悬挂机构，但是当时悲剧的现实是，能承载铁路车辆载荷的钢板弹簧也暂时无法生产，所以只能用一个纯刚性的铸铁结构来临时代替，等到弹簧生产出来之后进行替换。不少熟悉帝国初年历史的朋友们可能知道，当时有一种思想流派叫做“多铆蒸刚”——多就是在作战单位上安装多炮塔，铆就是采用铆接，蒸就是蒸汽动力，刚就是指这种刚性悬挂——部分元老是这种思想的信众，但是即便是最忠诚的“多铆蒸刚”的支持者也不愿意坐这时的铁路车辆，想想纯刚性悬挂的车辆跑在平顺度一般的轨道上，那是何等骨酥肉麻的体验？也正是因为刚性悬挂对轨道的冲击实在很大，本来设计能够承载轴重10吨的线路，不得不临时限制在轴重5吨，以保证不至于经常发生断轨事故。
+Manufacturing the axles and wheels of railway vehicles was also not an easy task at that time. Since the wheelset is a relatively critical structure, steel was used for its manufacture. The axle was manufactured using the process of making cannon barrels—the steel billet was heated, forged, then turned to the designed geometric dimensions, and a hollow axle structure was also bored to reduce its own weight. The wheel is composed of two parts, the wheel disc and the hub. The wheel disc uses a spoke structure—this is also to reduce its own weight—and is produced by the cast steel method. Since this part does not have high requirements for structural strength, some defects produced by casting are tolerable. The hub is manufactured by forging and then cutting. During assembly, the wheel disc is heated to expand, and the wheel disc is fitted onto the designated position of the axle; then the hub is heated, and the hub is fitted onto the wheel disc. Today, the wheels and axles of our EMUs are all machined; the wheels of freight cars are also produced by the integral rolled steel process, all of which are machined by special machinery under computer control. The fact that the Imperial Machinery Factory, in its early days, processed and assembled these workpieces that required fine geometric dimensions with rough general-purpose equipment, their painstaking effort and labor are worthy of admiration.
 
-　　制造铁路车辆的车轴和车轮在当时也并非易事。由于轮轴是比较关键的结构，采用了钢材进行制造，车轴采用了制造炮管的工艺——将钢坯加热，进行锻打，之后车削成设计的几何尺寸，还要镗出空心轴的结构来降低自重。而车轮是有轮辐和轮毂两部分构成，轮辐采用辐条结构——这也是为了降低自重，采用铸钢法生产的，由于这部分对结构强度要求不高，铸造产生的一些缺陷是可以容忍的。而轮毂是通过锻压之后进行切削制造的。在组装时，通过加热使得轮辐膨胀，将轮辐套在车轴的指定位置；之后对轮毂进行加热，再将轮毂套在轮辐上。今天，我们的动车组使用的车轮和车轴都是加工的；货车的车轮也是采用整体碾钢工艺，都是在计算机控制下由专用机械加工而成的。而帝国机械厂在初创之时通过粗糙的通用设备加工并装配这些需要精细几何尺寸的工件，其心血和劳力，是值得钦佩的。
+Among the various simple features, one of the few structures similar to our contemporary railway vehicles is the automatic coupler. The automatic coupler is composed of three parts: the coupler head, the coupler body, and the coupler tail. The thick front part of the coupler is called the coupler head. Inside the coupler head are the knuckle, the knuckle pin, the lock lift pin, the knuckle thrower, and the lock block. The rear part of the coupler is called the coupler tail. A vertical flat keyhole is opened on the coupler tail to connect with the draft gear. In order to achieve coupling or uncoupling, so that the vehicles can be connected or separated, the coupler has the following three positions, that is, the three states of the coupler: locked position—the position where the knuckle of the coupler is blocked by the lock block and cannot be turned outward. When two vehicles are coupled together, the coupler is in this position. Unlocked position—that is, the position where the lock block has been lifted, and the knuckle can be turned outward as long as it is subjected to a pulling force. When uncoupling, as long as one of the couplers is in the unlocked position, the two coupled vehicles can be separated. Fully open position—that is, the position where the knuckle has been fully turned outward. When two vehicles need to be coupled, as long as one of the couplers is in the fully open position, it can be coupled after colliding with the other vehicle's coupler. Among them, except for the pin components which are steel, the rest are made of cast iron. The coupler is installed at the end of the vehicle underframe by bolts.
 
-　　在各种简易当中，为数不多的和我们当代铁路车辆近似的结构当属自动车钩。自动车钩由由钩头，钩身、钩尾三个部分组成、车钩前端粗大的部分称为钩头，在钩头内装有钩舌、钩舌销，锁提销，钩舌推铁和钩锁铁。车钩后部称为钩尾，在钩尾上开有垂直扁锁孔，以便与钩尾框联结。为了实现挂钩或摘钩，使车辆连接或分离，车钩具有以下三种位置，也就是车钩三态：锁闭位置——车钩的钩舌被钩锁铁挡住不能向外转开的位置。两个车辆连挂在一起时车钩就处在这种位置。开锁位置——即钩锁铁被提起，钩舌只要受到拉力就可以向外转开的位置。摘钩时，只要其中一个车钩处在开锁位置，就可以把两辆连挂在一起的车分开。全开位置——即钩舌已经完全向外转开的位置。当两车需要连挂时，只要其中一个车钩处在全开位置，与另一辆车钩碰撞后就可连挂。其中除了销部件是钢材料，剩下都是铸铁制造的。车钩通过螺栓安装在车辆底架的端部。
+In fact, perhaps the most surprising thing is that the vehicle itself has no braking mechanism. Only the locomotive is equipped with a braking mechanism—its structure is also very simple. Two handles are installed on the side of the locomotive's steam dray. The lower part is directly connected to the brake shoes through a linkage, corresponding to the front and rear axles of the locomotive. When braking is required, the driver and the stoker pull the two handles backward, and the brake shoes press against the tread of the wheels, generating braking force. The magnitude of the braking force depends on the pulling force on the handles, especially during emergency braking, the driver and the stoker have to pull with all their might. To release the brake, you just need to push the handle forward. This was also a method that had to be used in the absence of steel ring springs. After calculation, under the limited gradient and traction tonnage of the railway at that time, relying solely on the braking force of the locomotive could still ensure safety. However, after stopping, it was necessary to insert wheel chocks under the wheels, otherwise it was very easy for a runaway accident to occur.
 
-　　其实，可能最令人惊讶的，还是车辆本身是没有制动机构的，只有机车上安装了制动机构——其结构也是非常简单，在机车锅驼机边上安装了两个手把，下部通过连杆直接连接闸瓦，对应于机车的前轴和后轴。在需要制动的时候，司机和司炉将两个手把向后拉，闸瓦就贴上车轮的踏面，产生制动力，制动力的大小取决于手把上的拉力，尤其是在紧急制动时，司机和司炉要拼命用力拉才可以。而制动缓解，只需要将手把向前推即可。这也是在没有钢圈弹簧的情况下不得也为之的方法。经过计算，在当时铁路的限制坡度和牵引定数的情况下，仅仅依靠机车的制动力还是可以保证安全的。但是，在停车后，必须向车轮下塞用于止轮的铁鞋，否则很容易发生溜逸事故。
+The length of this batch of vehicles of the Imperial Railway is 5 meters—this length is called a "unit length." That is to say, for a train composed of 10 vehicles, the total length of the train can be simply calculated as 50 meters by using the unit length. With the enrichment of the types of vehicles of the Imperial Railway, the lengths of different vehicles are obviously different. For example, the large-parts flatcar produced in the second year has a length of 12.5m, which is equivalent to 2.5 unit lengths. If 3 such large-parts flatcars are formed into a train, the "calculated length" of the whole train is 7.5, and the actual length can also be easily calculated as 37.5 meters. You may think this is superfluous, but in fact, the unit length plays the role of a "standard car"—through this, one can estimate how many standard cars the arrival and departure tracks of the railway and the train can accommodate, thereby estimating the transport capacity or weight of the train, etc. In fact, from then on, the general-purpose vehicles of the Imperial Railway are basically of equal length and equal weight. And with the advancement of railway technology, the length of general-purpose vehicles has also undergone several major adjustments, and correspondingly, the length represented by the unit of "unit length" has also been adjusted. Corresponding to the length of the vehicle, the wheelbase, that is, the distance between the two axles, is determined to be 2.6m—if the wheelbase is too short, the stability of the vehicle will be affected; when the vehicle passes through a curve, the flange of the wheel will form an angle with the track, called the "angle of attack." If the wheelbase is too large, the angle of attack will be large, which can easily lead to the flange climbing onto the track and causing a derailment accident. This wheelbase is a balance after considering these two factors.
 
-　　帝国铁道的这批车辆的长度为5米——这个长度被成为是“换长”，也就是说，对于编组为10辆车的列车，通过换长就可以简单的计算出列车的总长度为50米。随着帝国铁道车辆种类的丰富，显然不同车辆的长度是不一样的。比如第二年生产的大件平车，其长度是12.5m，折算之后就是2.5个换长。如果3辆这样的大件平车编组，整列车的“计长”就是7.5，同样能很容易的算出实际长度是37.5米。您可能认为多此一举，但是实际上换长起到了一个“标准车”的作用——通过这个可以估算铁路的到发线和列车能容纳多少辆标准车，从而估计铁路的运能或者列车的重量等。实际上自此往后，帝国铁道的通用车辆基本上都是等长和等重的，而随着铁路技术的进步，通用车辆的长度也经过几次大的调整，相应的，“换长”这个单位表示的长度也进行了调整。与车辆长度相对应，车辆的轴距，也就是两个车轴之间的距离，确定为2.6m——轴距太短，车辆的稳定性会收到影响；车辆在通过曲线的之后，车轮的轮缘会与轨道形成一个夹角，叫做“攻角”，轴距太大，攻角就比较大，容易导致轮缘爬上轨道而发生颠覆事故。这个轴距是考虑到这两个因素之后进行的平衡。
+The wheels and axles of the railway locomotives and vehicles were manufactured in the arsenal, the main accessories of the vehicle body were manufactured in the parts workshop of the machinery factory, the steam engine was manufactured in the workshop directly under the Industrial and Energy Committee, and the final assembly of the vehicles was carried out in the vehicle workshop of the machinery factory. Compared with the glorious and great 854 shipbuilding project in the early days of the Empire, the locomotives and vehicles of the railway did not have such an obvious driving force on the productive forces such as processing and manufacturing, materials, and design capabilities. However, if compared with other projects besides the 854 project, the manufacture of locomotives and vehicles for the Imperial Railway was still one of the largest projects, directly testing the cross-departmental collaboration and organizational capabilities. Thanks to the great planned economic system of the Empire, the various departments involved basically achieved the expected goals. But with the continuous development of the railway, driven by some Elders, the related industries of the Imperial Railway gradually separated from the general manufacturing departments and formed a relatively independent department.
 
-　　铁路机车车辆的车轮、车轴是在兵工厂制造的，车体的主要配件是在机械厂的零配件车间制造的，蒸汽机是在工能委直属的车间制造的，车辆的总装是在机械厂的车辆车间进行的。同帝国初期光辉伟大的854造船工程相比，铁路的机车车辆对加工制造、材料、设计能力等生产力要素的拉动力并不是那么明显，但是，如果除开854工程而和其他项目相比，帝国铁道的机车车辆制造仍然是数一数二的大项目，直接考验了跨部门的协作和组织能力。得益于帝国伟大的计划经济体制，所涉及的各个部门基本达到了预期的目标，但随着铁路的不断发展，在部分元老的推动下，帝国铁道的相关工业逐渐从通用制造部门分离，形成了一个相对独立的部门。
+While the Elders in charge of the machinery industry led engineers and workers to work painstakingly on the locomotives and vehicles, the Imperial Construction Corporation, which was responsible for the construction of the railway lines, encountered even greater trouble. Mr. Ma Qianzhu, the Chairman of the Imperial Executive Committee, personally determined the plan to embed the rails in the concrete of the ground floor. Obviously, this could prevent the tracks from becoming an obstacle for other official road vehicles—at that time, mainly handcarts, ox-carts, etc. However, it was not feasible to simply arrange the tracks to the gauge and then pour concrete, as this could not effectively fix them. The concrete would soon crack and break under stress, and a special structural design had to be adopted.
 
-　　在负责机械工业的元老带领工程师和工人为机车车辆呕心沥血的同时，负责铁路线路建设的帝国建筑总公司遇到了更大的麻烦。帝国执委会主席马千嘱先生亲自确定了要将铁轨嵌入到地坪的混凝土中的方案，显然，这样能够避免轨道成为其他官道车辆——当时主要是手推车、牛车等，通过的障碍，但是直接将轨道排成轨距后浇混凝土是不行的，这样根本无法有效的进行固定，很快混凝土就会在应力作用下开裂破碎，而必须采用特殊的结构设计。
+The earliest slab track of the Imperial Railway was born under such circumstances. Now some high-speed rail enthusiasts who are not very familiar with history believe that the slab track widely used on high-speed railways is "superior" and a representative of advancement, not comparable to the ballasted track laid on many freight lines. This view is wrong. In fact, as many Elders dedicated to science and technology pointed out at the time: there is no absolute superiority or inferiority between different technical routes. Which one to adopt should be determined by comprehensively considering environmental conditions, performance requirements, costs, and other factors. It was based on this consideration that after consultation between the Elders of the Construction Corporation and the railway, industrial, and other departments, it was decided to adopt a long-sleeper embedded slab track structure. The sleepers were made of hollow square cast wrought iron. At the position where the track was installed, there were two protruding bases. The rails were directly fixed to the long sleepers with steel fasteners and bolts.
 
-　　帝国铁道最早的无砟轨道就是在这样的情况下诞生的。现在有些对历史不甚了了的唯高速铁路爱好者认为，在高速铁路上广泛使用的无砟轨道就是“高人一等”，是先进的代表，不是很多货运线路上铺设的有砟轨道能够相比的，这种看法是错误的。实际上，正如当年很多致力于科技的元老指出的：不同的技术路线并没有绝对的优劣之分，采用何种，要综合考虑环境条件、性能需求、成本等因素进行确定。正是基于这种考虑，经过建筑总公司与铁道、工业等部门的元老进行协商之后，决定采用长枕埋入式无砟轨道结构，轨枕采用中空方形铸造熟铁，在安装轨道的位置有两个突出的底座，铁轨直接通过钢制的扣件和螺栓固定在长轨上。
+When pouring the ground floor, a space was reserved where the track needed to be laid. Reinforcing iron bars or bamboo bars were laid, and the 10-meter-long short-rail track panels with long sleepers installed were placed in sequence. The rail joints were connected with fishplates and bolts, and the plane shape of the track was adjusted to make it smooth, and the rail surface height was consistent with the ground floor surface. Wooden wedges were inserted to fix the line position, and the pouring was carried out section by section. During pouring, a groove was left on the inner side of the track to accommodate the passage of the wheel flange. This construction method well realized the previously proposed plan of embedding the rails in concrete. Its disadvantage was that adjusting the position of the track was more cumbersome. In addition, the labor quality of the initially recruited workers, or, according to a specialized term proposed later, the "migrant workers," was poor. In the initial stage of construction, the Elders in charge of railways and construction personally provided hands-on guidance at the construction site, which finally enabled these workers to carry out qualified construction. Another problem was that the use of iron long sleepers consumed a large amount of wrought iron, but it was still within the tolerable range of the Planning Council. This plan also had another problem, that is, the concrete covered the fixed fasteners and bolts. Once the track needed to be replaced, the concrete near the track had to be chiseled out, and after replacing the track, the concrete had to be restored. However, under the technical conditions at that time, this problem could only be tolerated.
 
-　　在浇筑地坪的时候，在需要铺设轨道的地方预留出来，铺入用于加强的铁筋或者竹筋，将安装了长枕的长度为10米的短轨轨排依次放入，用鱼尾板和螺栓将铁轨接头进行连接，并调整轨道的平面形状使之平顺，并且轨面高度和地坪表面一致，塞入木楔固定线路位形，并逐段进行浇筑。浇筑时留出轨道内侧容纳轮缘通过的槽道。这种工法很好的实现了之前提出来的将钢轨嵌入到混凝土中的方案，其缺点在于调整轨道的位形比较繁琐，加上初期招聘的工人，或者按照之后提出来的一个专有名词，“农民工”的劳动素质较差，在施工的初期负责铁道和建筑的元老亲自在工地进行了手把手式的帮教，终于使得这些工人能够进行合格的施工。另一方面就是由于采用铁质长轨，对熟铁的消耗量较大，不过尚在企划院能够容忍的范围内。这种方案还有一个问题，就是混凝土将固定的扣件、螺栓都覆盖了，一旦需要更换轨道，必须对铁轨附近的混凝土进行凿除，更换铁轨之后再对混凝土进行恢复，不过在当时的技术条件下，也只能容忍了这个问题。
+After leaving the workshop, the track was changed to a ballasted form. The ground was compacted as a roadbed, and ballast—that is, crushed stone with a certain particle size range produced by the quarry—was laid on the roadbed to form a trapezoidal ballast bed. Sleepers and rails were laid on the ballast bed. The sleepers were made of logs. The selected logs had a diameter between 25cm and 40cm. Logs that were too thin were not strong enough to bear the load as sleepers. Logs that were too thick had other uses and would be a waste of material to be used as sleepers, and would also cause a large change in the stiffness of the lower part, causing stress concentration inside the rails and easily leading to rail breaks. The logs were cut into 2.4-meter-long sections in the length direction, and then two cuts were made on the top and bottom to form two upper and lower surfaces, with a height of 15cm between them. The sleepers were lifted onto the ballast bed and laid out with a spacing of 0.67m, that is, 3 sleepers were laid every two meters. Then the rails were lifted onto the line, the gauge was set, tie plates were placed on the sleepers, and the rails and tie plates were fixed with spikes. The sections of rail were connected with fishplates. Then, tools such as crowbars were used to adjust the geometric position and shape of the line, and at the same time, the ballast bed was tamped. Tamping is when workers repeatedly insert and shake steel rods into the ballast bed, causing the loose ballast to settle and form a relatively stable and dense pile to effectively bear the load.
 
-　　轨道出了车间后就改为有砟的形式。将地面夯实作为路基，在路基上铺设采石场生产的道砟——也就是粒径在一定范围内的碎石，来构成梯形的道床，在到床上铺设轨枕和铁轨。轨枕是圆木做成的，采用的圆木是挑选出来的，直径在25cm到40cm之间。太细的圆木作为轨枕不足以承重，太粗的另有其他用途，用来做轨枕浪费材料，而且会使得下部刚度变化大，造成铁轨内部的应力集中，容易引发断轨。圆木被在长度方向上截成2.4米长的木段，之后上下个切两刀，形成上下两个表面，之间的高度为15cm。将轨枕抬到道床上摆好，间距为0.67m，也就是每两米放3根轨枕。之后将铁轨抬到线路上，定好轨距，在枕木上安放垫板，用道钉将钢轨和垫板进行固定，使用鱼尾板将各节铁轨连在一起。之后用橇杠等工具对线路的几何位置形态进行调整，同时，对道床进行捣固。捣固是工人手拿钢钎反复插入道床并晃动，使得虚浮的道砟下落，形成较为稳定密实的堆积状态，以有效承重。
-
-　　当时，帝国的钢铁工业还并不完整，甚至没有独立的生铁冶炼的能力，只能从前明国广东地区进口生铁，并独立将生铁进一步冶炼成熟铁和钢。此时钢产量非常有限，而需要用钢材的地方比比皆是，而相比钢，熟铁要富裕得多。因而经过权衡，采用了熟铁作为制造轨道的材料，所以上文，我称之为铁轨，而不是现在普遍的称呼“钢轨”。铁轨采用铸造工艺生产，其横截面与今天的钢轨类似，都是经过圆角处理的变体工字形，每米重30公斤，每段轨道5m，在轨道两端钻孔，用来和鱼尾板相连接；中间也有钻孔，工人在抬轨道的时候便于穿绳固定。因为铁轨的接头处会收到车轮的冲击，因而对局部采用淬火工艺，加强轨头的硬度。铁轨之间用鱼尾板和螺栓相连接。相比今天的钢轨，铁轨的承重能力是很差的，对这一点当时元老颇有怒其不争的感情。经过实地实验，确定这种轨道能承受轴重10吨的车辆以20公里的速度行驶；然而正如前文所说，考虑车辆是全刚性悬挂，所以还是限速到轴重5吨。
+At that time, the Empire's steel industry was not yet complete, and it did not even have the ability to independently smelt pig iron. It could only import pig iron from the Guangdong region of the former Ming country and independently further smelt the pig iron into wrought iron and steel. At this time, steel production was very limited, and steel was needed everywhere. Compared with steel, wrought iron was much more abundant. Therefore, after weighing the pros and cons, wrought iron was adopted as the material for manufacturing rails. So in the above, I call them iron rails, not the now common term "steel rails." The iron rails were produced by a casting process. Their cross-section was similar to today's steel rails, both being a modified I-beam with rounded corners. Each meter weighed 30 kilograms, and each section of track was 5m long. Holes were drilled at both ends of the track to connect with the fishplates; holes were also drilled in the middle to facilitate workers to pass ropes through for fixing when lifting the track. Because the joints of the iron rails would be impacted by the wheels, a quenching process was used locally to strengthen the hardness of the rail head. The iron rails were connected with fishplates and bolts. Compared with today's steel rails, the load-bearing capacity of iron rails was very poor, and the Elders at that time had a feeling of being angry at its failure to meet expectations. After field experiments, it was determined that this kind of track could withstand vehicles with an axle load of 10 tons traveling at a speed of 20 kilometers per hour; however, as mentioned before, considering that the vehicles had a fully rigid suspension, the speed was still limited to an axle load of 5 tons.
