--- a/_posts/2009-9-13-1-01300.md
+++ b/_posts/2009-9-13-1-01300.md
@@ -1,118 +1,119 @@
 ---
 layout: post
-title: 第十三节 老工人
+title: "Section 13: The Old Worker"
 category: 1
 path: 2009-9-13-1-01300.md
 tag: [normal]
 ---
 
-　　“[子山][y001]，我看你蛮有地主的气质的。”[文德嗣][y002]嘿嘿地笑着，“人都是王八之气，你是地主之威。”
+"[Zishan][y001], I think you have quite the temperament of a landlord," [Wen Desi][y002] chuckled. "People talk about a protagonist's aura, but you have the威 (wei - might/prestige) of a landlord."
 
-　　“可能俺们家祖上是地主吧。我一直以来的梦想就是有一片很大的庄园，种菜养鸡，搭个葡萄架，下面放把藤椅，拿个茶壶慢慢的喝茶……”
+"Maybe my ancestors were landlords. My dream has always been to have a large manor, grow vegetables, raise chickens, put up a grape trellis, place a wicker chair underneath, and slowly sip tea from a teapot..."
 
-　　“好享受啊，不过现在不也能办到么？”[文德嗣][y002]慢悠悠的说，“我们赚了好多钱，你的这点梦想，小意思。”
+"What a life. But can't you do that now?" [Wen Desi][y002] said slowly. "We've made a lot of money. Your little dream is a piece of cake."
 
-　　“可惜虫洞总有一天要消失的。”[萧子山][y001]舒展了一下筋骨，“这次感觉有很明显的能量波动。”
+"It's a pity the wormhole will disappear one day." [Xiao Zishan][y001] stretched his limbs. "I felt a very obvious energy fluctuation this time."
 
-　　“它要是机器猫的随意门就好了。”[文总][y002]笑了起来，
+"If only it were Doraemon's Anywhere Door," [Chief Wen][y002] laughed.
 
-　　[萧子山][y001]笑了起来：“我的话还没说完。还有几个清凉的美女在旁边打扇剥荔枝。一个熟女、一个御姐、一个小萝莉……”他想了一下，“其实高露洁这萝莉是个好胚子。”
+[Xiao Zishan][y001] laughed: "I haven't finished my sentence. And have a few cool and beautiful women fanning me and peeling lychees on the side. A mature woman, an older-sister type, and a little loli..." He thought for a moment, "Actually, that loli Gao Lujie is good material."
 
-　　“那丫头，”[文德嗣][y002]躺在沙发上剥开一个荔枝，“根本不是高青的女儿。”
+"That girl," [Wen Desi][y002] peeled a lychee while lying on the sofa, "is not Gao Qing's daughter at all."
 
-　　“嗯，DNA差异挺大。”[萧子山][y001]开始登记那一堆碗碟瓷器，每次穿越回来，都是他负责把贸易物品和所得登记造册。[王工][y003]又去他的小机械厂上班了，最近他上班的热情很高，高到让[文总][y002]和[萧子山][y001]都吃惊的地步——不但整天加班，回来还兴致勃勃。
+"Hmm, the DNA difference is quite large." [Xiao Zishan][y001] began to register the pile of bowls and porcelain. Every time they came back from a crossing, he was responsible for registering the trade goods and the income. [Engineer Wang][y003] had gone back to his small machinery factory. Recently, his enthusiasm for work was so high that it surprised both [Chief Wen][y002] and [Xiao Zishan][y001]—not only did he work overtime all day, but he was also full of excitement when he came back.
 
-　　“长相上完全没有父亲的遗传特征，和她的兄弟略有相似之处。还有那身高。”
+"In terms of appearance, she has absolutely no genetic traits of her father, and only a slight resemblance to her brother. And then there's her height."
 
-　　“[文总][y002]你看上这长腿小萝莉了？”
+"[Chief Wen][y002], have you taken a fancy to this long-legged little loli?"
 
-　　“看上也得先放着，正经事多了。先看看要做什么事情吧。”
+"Even if I have, I have to put it aside for now. There are too many important things to do. Let's first see what needs to be done."
 
-　　“当然是招兵买马了。”
+"Of course, it's recruiting troops and buying horses."
 
-　　在进行完第三次穿越贸易之后，他们掌握的现款已经有了二千多万，物资准备的条件已经达成。
+After completing the third transmigration trade, they had more than twenty million in cash, and the conditions for material preparation had been met.
 
-　　要招兵买马，第一个任务就是选择合适的集结出发点——需要一个专门的场所来接待那些将来报到的人。广州显然不是一个合适的地方。按照[文德嗣][y002]的想法，这个地点应该比较偏远，靠近未来穿越的地点，有足够的生活设施，容纳得下好几百人吃住，还要有较大的露天场地，最好是操场。
+To recruit troops and buy horses, the first task was to choose a suitable assembly point—a dedicated place was needed to receive those who would report for duty in the future. Guangzhou was obviously not a suitable place. According to [Wen Desi][y002]'s idea, this location should be relatively remote, close to the future transmigration point, have sufficient living facilities to accommodate several hundred people for food and lodging, and also have a large open-air field, preferably a sports ground.
 
-　　“要操场做什么？”[萧子山][y001]莫名其妙。
+"What do we need a sports ground for?" [Xiao Zishan][y001] was baffled.
 
-　　“锻炼身体啊，”[文德嗣][y002]看了下自己的胳膊和[萧子山][y001]的肚子，“别得不说，要逃命的时候，起码也得跑得过明朝的土人吧。”
+"To exercise, of course," [Wen Desi][y002] looked at his own arms and [Xiao Zishan][y001]'s belly. "If nothing else, when we need to run for our lives, we should at least be able to outrun the natives of the Ming Dynasty."
 
-　　当下兵分三路，[萧子山][y001]因为当过销售，对广东沿海大小城市比较熟悉，寻找基地的事情就归他了。[王洛宾][y003]则继续回他的机械厂上班。[文德嗣][y002]则留在广州准备下一次穿越贸易，同时主持讨论板上的网络讨论，同时发掘那些专业人员。第一批邀请名单，已经拟定出来了。
+So they divided the tasks into three. [Xiao Zishan][y001], having been a salesman, was relatively familiar with the large and small cities along the coast of Guangdong, so the task of finding a base fell to him. [Wang Luobin][y003] continued to work at his machinery factory. [Wen Desi][y002] remained in Guangzhou to prepare for the next trade, while also presiding over the online discussions on the forum and scouting for professionals. The first invitation list had already been drawn up.
 
-　　第四个加入委员会的人，并不来自网络，这多少有些出乎意料。
+The fourth person to join the committee did not come from the internet, which was somewhat unexpected.
 
-　　这天晚上[文德嗣][y002]刚刚看过讨论版，正考虑着下一步将和谁单独约谈，忽然看到[王洛宾][y003]走了进来，身着一件油渍斑斑的工作服，毫不在意的一屁股坐在沙发上，满脸兴奋之色。
+That evening, [Wen Desi][y002] had just finished reading the discussion board and was considering who to talk to individually next, when he suddenly saw [Wang Luobin][y003] walk in, wearing an oil-stained work uniform. He sat down on the sofa without a care, his face full of excitement.
 
-　　“[王工][y003]，你每天这么眉飞色舞的上班，有啥好事啊？”[文德嗣][y002]很好奇。
+"[Engineer Wang][y003], you go to work every day with such a radiant face. What good thing has happened?" [Wen Desi][y002] was very curious.
 
-　　“[文总][y002]，我想你见个人。”
+"[Chief Wen][y002], I want you to meet someone."
 
-　　“谁啊？”[文德嗣][y002]暗暗纳罕，[王工][y003]平时不爱说话，交际不多，而且他也不是本地人，怎么忽然要介绍人给他认识了？
+"Who?" [Wen Desi][y002] was secretly surprised. [Engineer Wang][y003] was usually not talkative and didn't socialize much. Moreover, he was not a local. Why did he suddenly want to introduce someone to him?
 
-　　“我的老板。”见[文德嗣][y002]有点没反应过来，他又补充了一句，“就是我上班地方的老板，姓展。”
+"My boss." Seeing that [Wen Desi][y002] didn't quite react, he added, "The boss of the place where I work, his surname is Zhan."
 
-　　“嗯？”
+"Hmm?"
 
-　　“我把穿越的事和他说了——”
+"I told him about the transmigration—"
 
-　　“什么？！”[文德嗣][y002]差点跳了起来。
+"What?!" [Wen Desi][y002] almost jumped up.
 
-　　“老文你别激动，别激动，”[王洛宾][y003]说，“他姓展，叫[展无涯][y004]，是个技师，手艺很好，车钳刨铣样样精通……”
+"Old Wen, don't get excited, don't get excited," [Wang Luobin][y003] said. "His surname is Zhan, his name is [Zhan Wuya][y004]. He's a technician, very skilled, proficient in lathing, clamping, planing, and milling..."
 
-　　“好了好了，说正事，他没把你当精神病或者骗子？”
+"Alright, alright, get to the point. He didn't think you were a mental patient or a scammer?"
 
-　　“这倒没有，他还想参加呢。”
+"Not at all. He wants to join."
 
-　　“参加？”[文德嗣][y002]一时间脑子没转过弯来，又反问了一次，“他也想去？”
+"Join?" [Wen Desi][y002]'s mind couldn't process it for a moment, and he asked again, "He wants to go too?"
 
-　　“对，那天我和他一起做一挺手摇加特林机关枪的时候……”
+"Yes. The other day, when he and I were making a hand-cranked Gatling gun together..."
 
-　　“什么！？”这次[文德嗣][y002]真得跳了起来，“[王工][y003]！！”
+"What?!" This time [Wen Desi][y002] really jumped up. "[Engineer Wang][y003]!!"
 
-　　赶紧压低了声音——虽然这房间的隔音非常好。
+He quickly lowered his voice—although the soundproofing in this room was very good.
 
-　　“你发疯了！造黑枪要坐牢的！”
+"Are you crazy! Building illegal firearms will land you in jail!"
 
-　　“没什么，反正到了大明总要造枪。先练练手。”[王洛宾][y003]一脸无所谓的样子，“我们搞机械的造两支枪算什么，小日本的九二步兵炮都有人造过。”
+"It's nothing. We'll have to build guns in the Ming Dynasty anyway. Just practicing our skills." [Wang Luobin][y003] had a nonchalant look on his face. "What's it for us machinery guys to build a couple of guns? Some people have even built the Japanese Type 92 infantry gun."
 
-　　“小日本的九二炮先不说，你这老板这么回事？”
+"Let's not talk about the Japanese Type 92 for now. What's the deal with this boss of yours?"
 
-　　“他特别欣赏你那个思路，说机加工这块都交给他好了，他准备把自己的厂子整个都搬过去。”
+"He particularly admires your line of thinking. He said to leave the machining part to him. He's preparing to move his entire factory over."
 
-　　[展无涯][y004]并不是[文总][y002]想象中满身油污的老工人，不过三十出头的模样，穿得是Ｔ恤，头发梳得整整齐齐，一双尺寸很大，皮肤粗燥的手才暴露出了他的职业性质。
+[Zhan Wuya][y004] was not the greasy old worker [Chief Wen][y002] had imagined, but a man in his early thirties, wearing a T-shirt, with his hair neatly combed. Only his large, rough hands revealed the nature of his profession.
 
-　　[文总][y002]平时因为工作性质关系，和这类的外协小加工厂接触很多。一聊之下，两个人很快就一些机加工技术问题深入的进行了探讨，共同语言拉近了双方的距离，很快便无话不谈了。
+Due to the nature of his work, [Chief Wen][y002] had a lot of contact with small subcontracting machine shops like this. Once they started talking, the two of them quickly delved into a deep discussion on some machining technology issues. Their common language brought them closer, and soon they were talking about everything.
 
-　　“[文总][y002]，这么说吧，咱们干机械这行的，从来没有造不出来的东西。”[展无涯][y004]的言谈里充满了工人阶级的自豪感，“就我那个小厂子好了，造坦克不敢说，造点迫击炮和机关枪还是小菜一碟。我念技校那会……”
+"[Chief Wen][y002], let me put it this way. For us in the machinery business, there's nothing we can't build." [Zhan Wuya][y004]'s words were filled with the pride of the working class. "Take my little factory, for example. I wouldn't dare say I can build a tank, but building some mortars and machine guns is a piece of cake. When I was in technical school..."
 
-　　说着他大谈了五分钟当年是如何做了一门迫击炮作为毕业设计作业的，接着又和[王洛宾][y003]探讨起造枪的问题——后来才知道[王洛宾][y003]之所以会和展老板如此迅速的建立起牢固的友谊，主要原因就是两人都是狂热的枪炮爱好者——[文德嗣][y002]赶紧打住了这二位的高谈阔论，免得让人听到了以为这是一个酝酿中的黑枪团伙。
+He then talked for five minutes about how he had built a mortar as his graduation project. Then he and [Wang Luobin][y003] discussed the issue of gun manufacturing—it was later learned that the main reason [Wang Luobin][y003] had established such a solid friendship with Boss Zhan so quickly was that both were avid firearms enthusiasts. [Wen Desi][y002] quickly stopped their grandiloquent talk, lest someone overhear and think this was a budding illegal firearms gang.
 
-　　他介绍了自己厂里的主要设备：剪扳机2台，折弯机80T1台，冲床63T1台、5T1台，车床2台、刨床1台，摇臂钻床1台，台钻3台，切割机1台、电焊机5台、点焊机1台、锯床1台，天车1台，磨床1台，砂轮机2台，氧焊1套，空压机1台、烘漆房设施1套。
+He introduced the main equipment in his factory: 2 shearing machines, 1 80T bending machine, 1 63T punch press, 1 5T punch press, 2 lathes, 1 planer, 1 radial drilling machine, 3 bench drills, 1 cutting machine, 5 electric welding machines, 1 spot welding machine, 1 sawing machine, 1 overhead crane, 1 grinding machine, 2 grinding wheels, 1 set of oxygen welding equipment, 1 air compressor, and 1 set of baking paint room facilities.
 
-　　“其实真要艰苦一点，有三大机就齐活了。”[展无涯][y004]说，“我读书的时候，爱看点军工回忆录，那时候搞军工的都是牛人，就靠个车床加台虎钳，一样能造枪造炮造机床。”他想了下，“不过材料很关键，没好材料的话，做出来的东西都会打折扣，有得连加工都没法加工。特别是一定要有合适的钢材。”
+"Actually, if we really have to rough it, the three great machines are all we need," [Zhan Wuya][y004] said. "When I was studying, I liked to read some military industry memoirs. The people in the military industry back then were real experts. With just a lathe and a vise, they could still build guns, cannons, and machine tools." He thought for a moment, "But materials are very crucial. Without good materials, the things you make will be compromised, and some can't even be processed. It's especially important to have suitable steel."
 
-　　[王洛宾][y003]说：“我们是要建立冶金工业的，炼铁、炼钢。”
+[Wang Luobin][y003] said, "We are going to establish a metallurgical industry, smelting iron and steel."
 
-　　“这方面我不懂了。能解决材料问题的话，机床除了能制造各种专业设备，最大好处是能自我复制，生产规模可以不断扩大，不怕损耗。算是可持续的发展吧。”
+"I don't know anything about that. If the material problem can be solved, besides being able to manufacture various professional equipment, the biggest advantage of machine tools is that they can self-replicate. The production scale can be continuously expanded, and we don't have to worry about wear and tear. It can be considered sustainable development."
 
-　　“的确，带再多的储备也有消耗完的那一天。”
+"Indeed, no matter how many reserves we bring, they will be consumed one day."
 
-　　“对，但是有些东西还是要带足，象车刀，一般是合金钢或者陶瓷烧结的，我们一开始造不出来，还有打磨用的砂轮，要特殊的材料，烧结也有技术。另外，油脂我不知道能不能用代用品，种类也蛮多的……”
+"Right. But there are still some things we need to bring enough of, like lathe tools, which are generally made of alloy steel or sintered ceramic. We won't be able to make them at the beginning. And grinding wheels for polishing, they require special materials, and the sintering also has its technology. Also, I don't know if substitutes can be used for lubricants, and there are many types..."
 
-　　“这些问题我们可以一个个的解决。”[文德嗣][y002]精神焕发，“老展你就先来负责工业这块的准备吧。”
+"We can solve these problems one by one," [Wen Desi][y002] said, invigorated. "Old Zhan, you can be in charge of the preparations for the industrial side for now."
 
-　　“没问题！”[展无涯][y004]的心情从来没有这样的充满激情。从厂里出来自己创业，摸爬滚打了也快十年了，虽然有了个小小的局面，但是生活却变得无聊乏味。每天疲于应付客户，此刻，他的眼前出现了一个前所未有的新世界，他斗志昂扬，决定在这个新世界里大干一场。
+"No problem!" [Zhan Wuya][y004]'s mood had never been so full of passion. Since leaving the factory to start his own business, he had been struggling for nearly ten years. Although he had achieved a small success, his life had become boring and dull. Every day he was tired of dealing with customers. At this moment, an unprecedented new world appeared before his eyes. His fighting spirit was high, and he decided to make a big splash in this new world.
 
-　　穿越委员会工业组就在这一天成立了，作为一种习惯的称呼，它被称为工业口。几天之后，工业口的另外一名成员也报到了，这便是后来在回忆录里与[展无涯][y004]激烈争夺穿越工业之父头衔的[马千瞩][y005]。
+The Industrial Group of the Transmigration Committee was established on this day. As a customary term, it was called the Industrial Front. A few days later, another member of the Industrial Front also reported for duty. This was [Ma Qianzhu][y005], who would later fiercely compete with [Zhan Wuya][y004] for the title of the father of transmigration industry in his memoirs.
 
-　　[马千瞩][y005]本来和[萧子山][y001]他们一样混同一个坛子，彼此有点脸熟。不过一开始他并没有参加这个虫洞的穿越讨论，而是在另一个帖子里醉心于他的全机械式计算中心系统——命名为齿轮五型——的架空设计。最初他以为[文总][y002]的虫洞和他的机械式计算机一样，纯属架空，后来他发现这伙人真得准备去明朝的时候，赶紧找熟人给报上了名。至于其动机，一点也不稀罕的：只有创造出了一个纯净的，没有芯片，自己成了权贵的新世界，才能实现他的理想：占地面积六千亩、八万马力功率、每秒运算二万次的豪华机械计算中心——这巨大的机械让他一想起来就心摇神曳。
+[Ma Qianzhu][y005] originally frequented the same forum as [Xiao Zishan][y001] and the others, and they were somewhat familiar with each other. However, at the beginning, he did not participate in this wormhole transmigration discussion, but was engrossed in his own fantasy design of a fully mechanical computing center system—named Gear V—in another thread. At first, he thought that [Chief Wen][y002]'s wormhole was purely fictional, just like his mechanical computer. Later, when he discovered that this group of people was really preparing to go to the Ming Dynasty, he quickly had a friend sign him up. As for his motivation, it was not at all strange: only by creating a pure world without microchips, where he himself became a powerful figure, could he realize his ideal: a luxurious mechanical computing center covering an area of six thousand mu, with a power of eighty thousand horsepower, and capable of twenty thousand operations per second—this huge machine made his heart tremble with excitement just thinking about it.
 
-　　总得来说，[马千瞩][y005]的爱好基本上是蒸汽朋克类的，关键词：多铆蒸刚。烟囱林立，锅炉轰鸣：煤炭燃烧时的黑烟，锅炉喷发出来的浓厚的蒸汽，钢铁碰撞时的巨大轰鸣，地面上奔驰着巨大的汽轮机火车，空中是多炮塔、硬壳、有无数隔舱用氦气的飞行炮艇……这便是他理想的世界。
+In general, [Ma Qianzhu][y005]'s hobbies were basically of the steampunk category. Keywords: multi-turreted, riveted, steam-powered, and rigid. A forest of smokestacks, roaring boilers: the black smoke from burning coal, the thick steam erupting from the boilers, the huge roar of colliding steel, giant steam turbine trains running on the ground, and multi-turreted, rigid-hulled, helium-filled flying gunboats with countless compartments in the air... this was his ideal world.
 
-　　接到[文德嗣][y002]的电话邀请之后，他毫不犹豫的收拾起行李，辞掉了画密集到吓人地步的公路设计图的职务，启程踏上了去广东的火车。
+After receiving the phone invitation from [Wen Desi][y002], he packed his bags without hesitation, quit his job of drawing frighteningly dense highway design drawings, and embarked on the train to Guangdong.
 
-　　他去的并不是广州，而是一个从未听说过的县级市。下了火车，还得转长途汽车。这个地方，就是[萧子山][y001]找到的出发基地。穿越者们将在这里秣马利兵，做好准备，踏上一去不回的征服平行世界的道路。
+He was not going to Guangzhou, but to a county-level city he had never heard of. After getting off the train, he still had to transfer to a long-distance bus. This place was the departure base that [Xiao Zishan][y001] had found. Here, the transmigrators would prepare their horses and sharpen their weapons, get ready, and embark on a one-way road to conquer a parallel world.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
