--- a/_posts/2009-9-17-1-01700.md
+++ b/_posts/2009-9-17-1-01700.md
@@ -1,142 +1,143 @@
 ---
 layout: post
-title: 第十七节 会议——娘子军
+title: "Section 17: The Meeting - The Women's Army"
 category: 1
 path: 2009-9-17-1-01700.md
 tag: [normal]
 ---
 
-　　会议途中，稍事休息，[萧子山][y001]的出去看到自己的娘子军们在休息室里嘻嘻哈哈的聚堆说话，她们多半会议开始不多久就溜出来了，这里也没什么好玩的，只能聊天了。年轻一点看到他过来还跑过来叫他“组长”“组长”的，似乎是觉得很好玩。
+During a short break in the meeting, [Xiao Zishan][y001] went out and saw his women's army gathered in the break room, laughing and talking. Most of them had probably slipped out not long after the meeting started. There wasn't much to do here, so they could only chat. The younger ones ran over to him when they saw him, calling him "Group Leader," "Group Leader," as if they found it very amusing.
 
-　　[萧子山][y001]把娘子军们召集在一起：“里面休会了，我们总务组来开个小会吧。”
+[Xiao Zishan][y001] gathered the women's army together: "The meeting inside is on a break. Let's have a small meeting for our General Affairs Group."
 
-　　“好吧。”“您说吧，组长，哈哈哈哈。”女人们聚在一起的疯劲都给激发出来了。
+"Alright." "Go ahead, Group Leader, hahahaha." The wild energy of women gathered together was unleashed.
 
-　　[萧子山][y001]坐在那里，等她们的嘻嘻哈哈的劲头慢慢过去——当她们的疯劲在男人那里得不到什么回应的时候就安静许多了
+[Xiao Zishan][y001] sat there, waiting for their giggling fit to slowly pass—when their wild energy received no response from the men, they became much quieter.
 
-　　“我们这个总务组呢，说白了就管后勤的。”他扫视了一眼总务组的女生们：一共八个人，除了那位五十多的大妈，基本都是二十三四岁到三十的，只有一个才二十出头，不过看起来还比较主流。
+"Our General Affairs Group, to put it bluntly, is in charge of logistics." He glanced at the girls in the General Affairs Group: there were eight of them in total. Except for the auntie in her fifties, they were basically all between twenty-three or four and thirty. Only one was in her early twenties, but she looked quite mainstream.
 
-　　她们填写的个人登记表他是看过的，除了那位五十多岁的大妈填的是“家庭妇女”之外其他六个都曾经就职过，[李元元][y007]是文秘，其他五个也都是类似的文职类工作。从事技术性工作的女性都分到了其他专业组去了，到总务组的，不用说都是没什么技能的女生。
+He had seen the personal registration forms they had filled out. Except for the auntie in her fifties who had put down "housewife," the other six had all been employed before. [Li Yuanyuan][y007] was a secretary, and the other five also had similar clerical jobs. The women with technical skills had all been assigned to other professional groups. Needless to say, the ones who ended up in the General Affairs Group were all girls with no special skills.
 
-　　也难怪这个总务组长的位置无人重视，这不等于就是“放牛班”么——换个好听的吧，就算是“庶务二课”。
+No wonder no one valued the position of head of the General Affairs Group. Wasn't this equivalent to a "remedial class"—or to put it more nicely, the "General Affairs Section 2"?
 
-　　“既然管后勤，肯定要做很多琐碎的杂事。我们就先从吃饭这个最基本的问题着手吧。总务组的第一件事情就是要负责伙食的供应。”
+"Since we are in charge of logistics, we will definitely have to do a lot of trivial miscellaneous tasks. Let's start with the most basic problem of eating. The first thing for the General Affairs Group is to be responsible for the food supply."
 
-　　“我从来没做过饭，最讨厌就是做饭了。”果然很猛，一个板砖就足够砸晕没经验的男人了。
+"I've never cooked in my life, and I hate cooking the most." As expected, she was fierce. One brick was enough to stun an inexperienced man.
 
-　　“我也没有，”有个女生怯生生的说，“不过可以学。”
+"Me neither," a girl said timidly, "but I can learn."
 
-　　“我倒不在乎做饭，只要你们敢吃！哈哈哈。”这位摆出一幅你们不怕死就叫姑奶奶做饭好了的架势来。
+"I don't mind cooking, as long as you dare to eat it! Hahaha." This one put on a posture of "if you're not afraid to die, then let this granny cook."
 
-　　“我倒是可以给大伙做饭，米饭、烙饼、擀条子都行。不过这么多人得准备大锅子。我也没做过食堂，不知道能不能行啊。”[曹大妈][y110]扎撒着两只手，有点犹豫。
+"I can cook for everyone. Rice, flatbread, noodles, all are fine. But for so many people, we need big pots. I've never worked in a canteen before, so I don't know if I can do it." [Auntie Cao][y110] spread her hands, a little hesitant.
 
-　　[萧子山][y001]知道[曹大妈][y110]的大名叫[曹顺花][y110]，初中毕业就下乡，很晚才回城。除了曾经在一家街道大集体企业做过几年的临时工之外，基本上就是当了一辈子家庭妇女。丈夫很早就去世，女儿是搞建筑的，离婚不久。生活经历坎坷，为人朴实坚韧，套用老话说就是一位“具有中国劳动妇女传统美德”的女性。
+[Xiao Zishan][y001] knew that [Auntie Cao][y110]'s full name was [Cao Shunhua][y110]. She had gone down to the countryside after graduating from junior high school and returned to the city very late. Except for working as a temporary worker in a neighborhood collective enterprise for a few years, she had basically been a housewife for her entire life. Her husband had passed away very early, and her daughter, who worked in construction, had recently divorced. Her life had been full of hardships, and she was a simple and resilient person. To use an old saying, she was a woman who "possessed the traditional virtues of Chinese working women."
 
-　　“我们订盒饭解决吧。”一位年龄较长的女性建议着，“这么多人呢，而且以后还会更多，我们都去做饭也不够。”
+"Let's just order boxed lunches," a slightly older woman suggested. "There are so many people, and there will be more in the future. It won't be enough even if we all cook."
 
-　　“盒饭质量不好，这个大家都知道。”[萧子山][y001]笑着摇头，“当个午饭什么的糊弄一下可以，我们要在这里呆上个半年一年的，天天吃盒饭？！”他缓了一口气，带着诱导性的笑容，“大家也都希望自己的男朋友、家人吃好吧？”
+"The quality of boxed lunches is not good, everyone knows that." [Xiao Zishan][y001] shook his head with a smile. "It's fine to make do with it for lunch or something, but we're going to be here for half a year to a year. Are we going to eat boxed lunches every day?!" He took a breath and said with an enticing smile, "Doesn't everyone also hope that their boyfriends and families eat well?"
 
-　　要是换个地方，这套说辞和对牛弹琴也差不多。但是这里不同，这些女人愿意为了感情去另一个时空，对自己男人的重视程度应该比一般的情侣高得多。
+If it were another place, this line of reasoning would be like playing a lute to a cow. But this place was different. These women were willing to go to another time and space for the sake of their relationships. The importance they placed on their men should be much higher than that of ordinary couples.
 
-　　至于他为什么要费事坚持办食堂，主要还是为了穿越之后的伙食供应积累经验。17世纪的海南是没有快餐公司的。
+As for why he went to the trouble of insisting on running a canteen, it was mainly to accumulate experience for the food supply after the transmigration. There were no fast-food companies in 17th-century Hainan.
 
-　　女人们对视了一下，没吭气。
+The women looked at each other and said nothing.
 
-　　“赵晓芹，你是餐饮企业里做采购的吧？”
+"Zhao Xiaoqin, you used to be a purchaser in a catering company, right?"
 
-　　“对，五年采购经验。”这位年近三十的女性长长的叹息了一声。
+"Yes, five years of purchasing experience." This woman, nearly thirty, let out a long sigh.
 
-　　“那你可以负责采购，”[萧子山][y001]提议道，“直接找供应商打交道，这方面你肯定专业。”
+"Then you can be in charge of purchasing," [Xiao Zishan][y001] proposed. "Dealing directly with suppliers, you are definitely a professional in this area."
 
-　　赵晓芹迟疑了一下：“这里的供应商我不熟悉啊。”
+Zhao Xiaoqin hesitated for a moment: "I'm not familiar with the suppliers here."
 
-　　“没关系，既然是你的本行，换一个地方对你这样的专业人士来说只是小菜一碟吧。”[萧子山][y001]知道要鼓励一个人干活，除了经济刺激，最有效的就是肯定他作为一个职业者的价值。
+"It doesn't matter. Since it's your profession, changing to a new place should be a piece of cake for a professional like you." [Xiao Zishan][y001] knew that to encourage someone to work, besides economic incentives, the most effective way was to affirm their value as a professional.
 
-　　“那好，我就试试看吧。不过我有个要求。”
+"Alright then, I'll give it a try. But I have a request."
 
-　　“说吧。”
+"Go ahead."
 
-　　“我需要一间办公室，电脑我自己有，得有一门电话，对了，还要传真机。如果有条件，最好能通网络。”
+"I need an office. I have my own computer, but I need a phone line, and oh, a fax machine. If possible, it would be best to have internet access."
 
-　　[萧子山][y001]很快的在笔记本上记下她的要求。
+[Xiao Zishan][y001] quickly jotted down her requests in his notebook.
 
-　　“网络有点问题，目前还没申请下来。电话和办公室没问题。我逐一给你解决。”
+"The internet is a bit of a problem, we haven't applied for it yet. The phone and office are no problem. I will solve them for you one by one."
 
-　　“我需要你们订出菜谱……食谱来，这样我才能估计采购量。”她似乎在琢磨什么似得自言自语起来，“蔬菜、肉类、禽蛋……”
+"I need you to draw up a menu... a meal plan, so that I can estimate the purchase volume." She seemed to be pondering something as she muttered to herself, "Vegetables, meat, poultry, eggs..."
 
-　　好，这样就有点干活的气氛了。就是要这样。
+Good, this was starting to feel like a work atmosphere. This was what he wanted.
 
-　　“晓芹姐，不用买这些吧？我们可以订购净菜啊。”
+"Sister Xiaoqin, we don't need to buy all that, do we? We can order pre-prepped vegetables."
 
-　　对，净菜。[萧子山][y001]想，我也是这么打算的，有人提出来说明大家还是蛮聪明的。净菜的好处就在于不需要太多的加工，直接烹调就能成菜，省去了烦琐的分拣、清洗、加工的手续。这对好逸恶劳的现代人来说是再好不过。
+Right, pre-prepped vegetables. [Xiao Zishan][y001] thought, *that was my plan too*. The fact that someone brought it up showed that everyone was quite smart. The advantage of pre-prepped vegetables was that they didn't require much processing and could be cooked directly into dishes, saving the tedious procedures of sorting, washing, and processing. This was perfect for modern people who were fond of leisure and averse to labor.
 
-　　要是真按办单位食堂那样采购回一堆鸡鸭鱼肉和蔬菜来，光收拾原料就会引起这群女人之间的极大矛盾。
+If they really bought a pile of chickens, ducks, fish, meat, and vegetables like a regular company canteen, just preparing the raw materials would cause great conflict among this group of women.
 
-　　“哦，对，这样方便。”赵晓芹也笑了，“不然拣菜洗菜就是件麻烦事。”她脸上那种颓唐的神情不见了，“那这样我这几天就去次市区，拿一些净菜公司的产品目录，也顺便看看市场上的价格，回来就能核每个人的标准了。”
+"Oh, right, that's convenient." Zhao Xiaoqin also smiled. "Otherwise, picking and washing vegetables would be a troublesome task." The decadent look on her face disappeared. "In that case, I'll go to the city in a few days, get some product catalogs from the pre-prepped vegetable companies, and also check the market prices. When I come back, I can calculate the standard for each person."
 
-　　“行。”[萧子山][y001]暗暗高兴。
+"Alright." [Xiao Zishan][y001] was secretly pleased.
 
-　　“那我还要一个人帮手，可以吗？”赵晓芹犹豫了一下，“只有我一个人经手不大合适。”
+"Then I need one more person to help me, is that okay?" Zhao Xiaoqin hesitated for a moment. "It's not quite appropriate for me to handle it all by myself."
 
-　　果然是职场老手，知道进退。既然知趣，[萧子山][y001]也要表达出充分尊重对方的意思出来：
+She was indeed a veteran of the workplace, knowing when to advance and when to retreat. Since she was so tactful, [Xiao Zishan][y001] also had to show his full respect for her:
 
-　　“你选一个吧。”
+"You choose one."
 
-　　“我来给你帮手吧。”刚才提出净菜建议的小女孩主动请战，“我会说广东话。”
+"I'll help you." The little girl who had just suggested pre-prepped vegetables volunteered. "I can speak Cantonese."
 
-　　“好，你来帮我。不过组长，我们的经费和报销流程怎么走呢？”
+"Alright, you help me. But Group Leader, what about our funding and reimbursement process?"
 
-　　[萧子山][y001]说了下整个流程，在长达一年的准备期内，建立一套简易但是完善的行政和财务体系是很有必要，而且在未来有重要的借鉴作用。
+[Xiao Zishan][y001] explained the whole process. During the year-long preparation period, it was very necessary to establish a simple but complete administrative and financial system, and it would serve as an important reference in the future.
 
-　　“那我知道了，所有东西都是货到就付款，对吗？”
+"Then I understand. Everything is cash on delivery, right?"
 
-　　“对。”这是为了避免和供货商进行太多的接触，只是送货的话，到门口卸一下就完事了。
+"Right." This was to avoid too much contact with the suppliers. If it was just delivery, they could just unload at the gate and be done with it.
 
-　　“曹大姐，这火头军的领军人物就看您了。”[萧子山][y001]用十万分的诚恳语气说，“我们年轻人实话说做饭手艺都不怎么样。办食堂得让大伙都满意。您的手艺还不错，这方面就交托给您了。”
+"Big Sister Cao, the leadership of this kitchen army is up to you." [Xiao Zishan][y001] said with a tone of utmost sincerity. "To be honest, we young people are not very good at cooking. Running a canteen has to satisfy everyone. Your skills are quite good, so I'll entrust this aspect to you."
 
-　　“看你说得，萧……组长……”大概对组长这个头衔不大适应。
+"Look at you, Xiao... Group Leader..." She was probably not used to the title of Group Leader.
 
-　　“您就叫我[子山][y001]好了。”
+"You can just call me [Zishan][y001]."
 
-　　“那我就叫您[子山][y001]了，”曹大姐笑得挺开心，“做饭也没什么难得，多看几回就知道了。就是我那手艺都是北方味的，不知道南方的同志吃得惯不，听说烧菜还得放糖？”
+"Then I'll call you [Zishan][y001]," Auntie Cao smiled happily. "Cooking is not that difficult. You'll know after watching a few times. It's just that my skills are all northern style. I don't know if the comrades from the south are used to it. I heard you have to add sugar when you cook?"
 
-　　“我想也没什么问题吧。”[萧子山][y001]笑了笑，“现在大家的口味都不那么特殊了。我们采购的是净菜，大众化的口味，做起来也容易。你就给大家换换花样，做点主食什么的就可以了。”
+"I don't think it will be a problem," [Xiao Zishan][y001] smiled. "Everyone's tastes are not so particular now. We are purchasing pre-prepped vegetables with popular flavors, so they are easy to cook. You can just provide some variety for everyone, make some staple foods and so on."
 
-　　“好！这个我拿手。”
+"Alright! I'm good at that."
 
-　　“赵晓芹，还要添置一些厨房设备，这个你多少懂一点，也去看看吧。”
+"Zhao Xiaoqin, we also need to add some kitchen equipment. You know a little about this, so go and take a look."
 
-　　她在自己的小本子上记了一笔，“最多要供应多少人？”
+She made a note in her small notebook, "What is the maximum number of people we need to supply for?"
 
-　　“五百到六百吧。”[萧子山][y001]似乎有点为难，“设备尽量节约点买，很多东西，象电饭锅什么的，怕到时候拿过去用不上。”
+"Five to six hundred, I guess." [Xiao Zishan][y001] seemed a little troubled. "Let's try to be economical when buying the equipment. Many things, like rice cookers and so on, I'm afraid we won't be able to use them when we get there."
 
-　　“哦，没关系的，”她说，“厨房设备是可以租用的。目前我们就都只租不买好了。”
+"Oh, that's okay," she said. "Kitchen equipment can be rented. For now, let's just rent everything and not buy."
 
-　　[萧子山][y001]点点头，果然是专业对口才是最强大的。团体的用人，就是要人尽其用。
+[Xiao Zishan][y001] nodded. As expected, being a professional in one's field was the most powerful. In a group, one must make the best use of everyone's talents.
 
-　　他把食堂的相关的工作都安排好，总务组除了自己的本职工作外，每天都要在食堂帮忙。此外，其他的穿越者，则按四人一组，轮番在食堂进行帮厨。总务组则因为专职从事后勤服务的贡献，每周单独聚餐一次，可带男友或家人，标准为每人20元。
+He arranged all the work related to the canteen. In addition to their own duties, the General Affairs Group had to help in the canteen every day. In addition, the other transmigrators would take turns helping in the kitchen in groups of four. The General Affairs Group, because of their dedicated contribution to logistics services, would have a separate dinner party once a week, and could bring their boyfriends or family members, with a standard of 20 yuan per person.
 
-　　这点额外的福利让大家都比较满意。
+This little extra benefit made everyone quite satisfied.
 
-　　“[李元元][y007]。”
+"[Li Yuanyuan][y007]."
 
-　　“到！组长。”女孩子做出一个立正的姿势来。
+"Here! Group Leader." The girl stood at attention.
 
-　　“你还要负责全部的文书工作，包括人事材料、会议记录整理，各个组的报告、申请，财务报表等等这些都要汇总成册，作为档案保存，明白了吗？”
+"You will also be responsible for all the clerical work, including personnel materials, meeting minutes organization, reports and applications from various groups, financial statements, and so on. All of these must be compiled into volumes and preserved as archives, understand?"
 
-　　“明白！组长。”
+"Understood! Group Leader."
 
-　　“方忆静你负责各种生活用品的配给工作，还有就是宿舍管理和卫生包干的分配。”
+"Fang Yijing, you are responsible for the distribution of various daily necessities, as well as dormitory management and the allocation of sanitation duties."
 
-　　“我？”被点到名的女人吃了一惊。
+"Me?" The woman whose name was called was taken aback.
 
-　　“你不是曾经当过保育老师吗？”
+"Weren't you a nursery teacher before?"
 
-　　“那是小孩子啊。这里很多都是男人——”
+"That was for little children. There are many men here—"
 
-　　“没关系的，呵呵，有女人在，他们会比较注意自己的形象，不会搞得太邋遢。”
+"It's okay, hehe. With women around, they will pay more attention to their image and won't be too sloppy."
 
-　　短暂的半小时休息时间，[萧子山][y001]大体把总务组的各个环节都建立起来。采购：赵晓芹；食堂：[田顺花][y110]；宿舍：方忆静；文秘：[李元元][y007]。每个人配一名助手。[萧子山][y001]想，这样穿越之后，如何组织后勤也就有章可循了。
+In the short half-hour break, [Xiao Zishan][y001] had basically established all the links of the General Affairs Group. Procurement: Zhao Xiaoqin; Canteen: [Tian Shunhua][y110]; Dormitories: Fang Yijing; Secretariat: [Li Yuanyuan][y007]. Each person was assigned an assistant. [Xiao Zishan][y001] thought, this way, after the transmigration, there would be a system to follow for organizing logistics.
+
 [y001]: /characters/y001 "萧子山"
 [y007]: /characters/y007 "李元元"
 [y110]: /characters/y110 "曹顺花"
