--- a/_posts/2009-9-2-1-00200.md
+++ b/_posts/2009-9-2-1-00200.md
@@ -1,126 +1,127 @@
 ---
 layout: post
-title: 第二节 文总的野望
+title: "Section 2: Chief Wen's Ambition"
 category: 1
 path: 2009-9-2-1-00200.md
 tag: [normal]
 ---
 
-　　[文德嗣][y002]大致介绍了他自己单独穿过去的经历。从他家的洗手间穿过去的异时空是在某个山丘下，正在一条小河畔，从土地的开发程度看，这是一个相当繁荣的农业区。地貌和植被应该就是华南，正当他彷徨着要不要冒险深入，看看有没有村落可以探查的时候，意想不到的事情发生了：
+[Wen Desi][y002] briefly described his experience of crossing over alone. The other side of the wormhole from his bathroom was at the foot of a hill, by a small river. Judging from the level of land development, it was a fairly prosperous agricultural area. The landforms and vegetation suggested it was Southern China. Just as he was hesitating whether to venture deeper to see if there were any villages to investigate, the unexpected happened:
 
-　　一伙古装的士兵，在骑马的军官带领下，把十多个乡民模样的人押解到河边，随即开始了屠杀。
+A group of soldiers in ancient costumes, led by a mounted officer, escorted more than a dozen people who looked like villagers to the riverbank and immediately began a massacre.
 
-　　虽然[文德嗣][y002]也在网络上看过一些相当血淋淋的照片，但是在三十米外近距离实景观看，其震撼程度还是无与伦比。
+Although [Wen Desi][y002] had seen some rather bloody photos on the internet, watching it happen in real life from less than thirty meters away was an unparalleled shock.
 
-　　最后士兵们割下了人头，随手丢了一些破损的武器在尸体周围，簇拥着军官扬长而去。
+Finally, the soldiers cut off the heads, casually tossed some broken weapons around the corpses, and then rode off, surrounding their officer.
 
-　　“……幸亏我穿着迷彩服，不然还真玄。”[文德嗣][y002]说起来还心有余悸，“离我最近的那几个，还不到十米远。”
+"...Fortunately, I was wearing camouflage, otherwise it would have been really dangerous." [Wen Desi][y002] still had lingering fears as he spoke. "The closest ones were less than ten meters away from me."
 
-　　异时空给[文德嗣][y002]留下的第一印象是空气好，第二印象就是性命堪忧。
+The first impression the other spacetime left on [Wen Desi][y002] was that the air was good. The second impression was that his life was in peril.
 
-　　[文德嗣][y002]打开笔记本，给他们看现场拍摄的照片。血肉模糊的无头尸体在900万像素单反镜头的演绎下逼真得让人想吐。
+[Wen Desi][y002] opened his laptop and showed them the photos taken on site. The bloody, headless corpses, rendered by the 9-megapixel DSLR lens, were so realistic they made one want to vomit.
 
-　　“我还找到了一些散落在周边的铜钱。”[文德嗣][y002]拿出了一个塑料袋，里面装着十几枚铜钱，“有好几种，请人看了，最晚的是天启通宝。”
+"I also found some copper coins scattered around." [Wen Desi][y002] took out a plastic bag containing a dozen or so copper coins. "There are several kinds. I had someone look at them. The latest one is a Tianqi Tongbao."
 
-　　“也有可能是崇祯年间。”
+"It could also be from the Chongzhen era."
 
-　　“至少是在天启二年之后了。”[萧子山][y001]很有把握的说。“光宗只做了几个月皇帝就驾崩了，天启元年铸造的是他爹的泰昌通宝。第二年才开始铸造天启年号的。要是考虑到铸造和流通也需要时间的话，可以推算到天启三年之后。”
+"It's at least after the second year of Tianqi," [Xiao Zishan][y001] said with confidence. "The Guangzong Emperor was on the throne for only a few months before he died. In the first year of Tianqi, they were minting his father's Taichang Tongbao. They only started minting coins with the Tianqi reign title in the second year. If you consider that minting and circulation also take time, you can estimate it to be after the third year of Tianqi."
 
-　　“不过这个时代推测还是宽泛了一点。这兄弟俩在位有二十多年。”
+"But that's still a rather broad estimate for the era. Those two brothers were on the throne for more than twenty years."
 
-　　“我想应该就是天启，最多也就是崇祯初年。崇祯通宝的各地都有大量铸造，流传范围很广，没可能只有天启钱的。”
+"I think it should be the Tianqi era, or at most the early Chongzhen era. Chongzhen Tongbao coins were minted in large quantities all over the country and had a wide circulation. It's impossible that there would only be Tianqi coins."
 
-　　确定了时代，我们到底打算做什么？
+Now that the era was determined, what did they intend to do?
 
-　　一个通向异时空的虫洞，对于科学界来说具有里程碑的意义，卫生间里的三个人显然都不是物理学家，诺贝尔奖是没份的。如果说要作为重大新闻的话，他们中又没有一位是媒体业的，最多只能算是新闻中的当事人。当然，作为发现者，[文总][y002]肯定会在新闻里被稍微提到一下。除此之外，这几个人都相当阴谋论的想到，鉴于此事可能会带来巨大的后果，虫洞的存在很有可能会被完全掩盖——正如美国人一直怀疑有个五十一区一样——这样的话，他们的前景就大大的不妙了。
+A wormhole to another spacetime was a milestone for the scientific community, but the three men in the bathroom were clearly not physicists; a Nobel Prize was out of the question. If it were to be major news, none of them were in the media industry; at most, they would be the subjects of the news. Of course, as the discoverer, [Chief Wen][y002] would surely be mentioned briefly in the news. Beyond that, these men, all being quite conspiratorially minded, thought that given the potentially huge consequences, the existence of the wormhole would most likely be completely covered up—just as Americans have always suspected about Area 51. In that case, their prospects would be very bleak.
 
-　　除了虫洞的产权人——无主之物归发现者所有，所以[文德嗣][y002]可以算作是虫洞的所有者——之外，另二个人心里都很明白这是一次机会，[文德嗣][y002]要是真想去得什么物理奖或者搞他的“单人双向低调穿越”的话，是无论如何也不会去发那个帖子的。
+Besides the owner of the wormhole—unclaimed property belongs to the discoverer, so [Wen Desi][y002] could be considered the owner of the wormhole—the other two men understood very well that this was an opportunity. If [Wen Desi][y002] had really wanted to win some physics prize or pursue his "solo, two-way, low-profile transmigration," he would never have made that post.
 
-　　这个机会又多大？正如[文总][y002]说的，大到可能拥有一个世界——另一个位面上的17世纪。
+How big was this opportunity? As [Chief Wen][y002] said, it was big enough to potentially own a world—the 17th century on another plane of existence.
 
-　　想到这点，呼吸都粗了起来。
+At this thought, their breathing grew heavy.
 
-　　在一番简单的讨论之后，在[文德嗣][y002]家的洗手间里，成立了最初的执行委员会，并且随即产生了第一号文件。在新世纪发现史中，该会议被称为“洗手间会议”。
+After a brief discussion, in the bathroom of [Wen Desi][y002]'s home, the initial Executive Committee was formed, and its first document was immediately produced. In the history of the discovery of the new century, this meeting was known as the "Bathroom Meeting."
 
-　　会议通过的纲领：建立一个新世界！
+The program passed by the meeting: Establish a new world!
 
-　　如何去创建他们的新世界？古人不是没思维的NPC，在智慧上并不输于现代人，既不缺少勇气，也不缺少力量，论到对环境的适应性，更是远非娇贵的现代人所能相比。这三个人虽然都爱看穿越架空小说，起码还知道自己没有什么王八之气的。
+How to create their new world? The ancients were not mindless NPCs. In terms of intelligence, they were not inferior to modern people. They lacked neither courage nor strength, and when it came to adapting to the environment, they were far superior to the delicate people of modern times. Although these three men all loved to read transmigration and alternate history novels, they at least knew they didn't possess any kind of protagonist aura.
 
-　　穿越众唯一能胜过他们的，便是比他们多300年文明的积累。
+The only thing the transmigrators could surpass them in was the accumulation of 300 more years of civilization.
 
-　　“规模化、标准化，”[王洛宾][y003]说，“是制胜的法宝。工业化的社会，足以击败任何一个古代社会。”
+"Scale and standardization," said [Wang Luobin][y003], "are the magic weapons for victory. An industrialized society is enough to defeat any ancient society."
 
-　　召集大批掌握现代技术、管理方法的穿越者，携带现代工业设备和技术，一起穿越到那个时空，建立一个基地，完成基本的工业化，形成一套完备的工业体系，以此为出发点制霸全球。
+The plan was to gather a large number of transmigrators who had mastered modern technology and management methods, carry modern industrial equipment and technology, and travel together to that spacetime. They would establish a base, complete basic industrialization, form a complete industrial system, and use this as a starting point to dominate the globe.
 
-　　千里之行始于足下，不管这个目标如何的宏伟，饭还是得一口一口的吃。小组经过讨论，确定近期的目标是二个：
+A journey of a thousand miles begins with a single step. No matter how grand this goal was, they still had to eat one bite at a time. After discussion, the group determined two immediate goals:
 
-　　招集穿越众和筹集购买物资设备的钱。
+Recruit more transmigrators and raise money to purchase materials and equipment.
 
-　　[文德嗣][y002]决定首先建立起一个skype的聊天群，作为联系之用，原有的帖子，现在已经非常的火热，他也不再做任何说明，只简单的加了上这个群号和一个备用的电子邮件地址。然后就把帖子锁了——大家一致认为从现在起不宜引人注目。
+[Wen Desi][y002] decided to first set up a Skype chat group for communication. The original post was already very popular. He made no further explanations, simply adding the group number and a backup email address. Then he locked the post—they all agreed that it was not advisable to attract attention from now on.
 
-　　至于钱，虽然这三个人还算有点积蓄，加起来不到一百万。一百万人民币去完成工业化——哪怕是工业革命时期的工业化，也太过科幻。
+As for money, although the three of them had some savings, it added up to less than a million yuan. A million RMB to achieve industrialization—even the industrialization of the Industrial Revolution era—was too much of a fantasy.
 
-　　当然，理论上后续参加的人也会带来资金，但是不会多到哪里去。
+Of course, in theory, subsequent participants would also bring funds, but it wouldn't be a huge amount.
 
-　　通过双向穿越，利用两边的时空物价差来筹集经费，大概是比较现实的快速赚钱方法了。
+Using the two-way transmigration to exploit the price differences between the two spacetimes was probably a more realistic way to make money quickly.
 
-　　用现代产品在古代获得暴利，这是所有穿越小说里屡试不爽的发财妙法。大家马上想到了玻璃镜、玻璃杯、火柴、手表之类的穿越专用财宝。无数的穿越者们正是依靠这些才在异时空发家致富，掘到第一桶金，迈上王霸之旅的。
+Using modern products to make huge profits in ancient times was a tried-and-true method of getting rich in all transmigration novels. They immediately thought of transmigration-specific treasures like glass mirrors, glass cups, matches, and watches. Countless transmigrator predecessors had relied on these to make their fortunes in other spacetimes, dig up their first pot of gold, and embark on their journey to hegemony.
 
-　　[萧子山][y001]贡献出了他多年来因为贪图小便宜而积攒起来的大量促销赠品：
+[Xiao Zishan][y001] contributed the large quantity of promotional gifts he had accumulated over the years due to his penchant for petty gains:
 
-　　带镜子的塑料粉盒、密胺制的碗勺筷子、小水果刀、塑料布的厨房围裙、晴纶的帽子围巾手套套装、玻璃的马克杯、塑料饭盒、毛巾……林林总总的装了有三四箱子。这些在义乌定做的小商品，丑陋的印着各式各样的公司LOGO，此刻在这几位眼中都成了闪闪发亮的金子。
+Plastic powder boxes with mirrors, melamine bowls, spoons, and chopsticks, small fruit knives, plastic kitchen aprons, acrylic hat-scarf-glove sets, glass mugs, plastic lunch boxes, towels... all in all, three or four boxes full. These small commodities, custom-made in Yiwu, were ugly and printed with various company logos. But at this moment, in the eyes of these men, they were all shining gold.
 
-　　17世纪的威尼斯玻璃镜即使在欧洲也是奢侈品，亚洲根本没有，从这点来看，镜子是一种垄断，再比如那些摔不坏的碗碟、透明的饭盒……包括他们刚才喝掉的纯净水留下的空瓶子，随便哪一样都是那个时空没有的新东西，理论上说，他们愿意卖多少钱都可以：一百两一个粉盒，二千两一个杯子，一百两一个碗……多少穿越前辈不就是这么干的……
+In the 17th century, Venetian glass mirrors were a luxury even in Europe, and they didn't exist in Asia at all. From this point of view, mirrors were a monopoly. Then there were the unbreakable bowls and dishes, the transparent lunch boxes... including the empty bottles of purified water they had just drunk. Any of these were new things that didn't exist in that spacetime. In theory, they could sell them for any price they wanted: a hundred taels of silver for a powder box, two thousand taels for a cup, a hundred taels for a bowl... countless transmigration predecessors had done just that...
 
-　　这三个人都被金灿灿的未来激动的血压升高。[文德嗣][y002]甚至开始有些后悔了——也许冒险一个人搞双向穿越也能统一世界。
+The three men were all flushed with excitement at the golden future. [Wen Desi][y002] even began to have some regrets—perhaps he could have unified the world by adventuring alone with two-way transmigration.
 
-　　“可我们就这么过去，一到城门口就会给当成倭寇抓到海防同知衙门去。”[王洛宾][y003]想起了现实问题。
+"But if we just go over like this, we'll be arrested as Japanese pirates at the city gate and taken to the coastal defense subprefect's yamen," [Wang Luobin][y003] thought of a practical problem.
 
-　　“广州有海防同知衙门吗？”
+"Is there a coastal defense subprefect's yamen in Guangzhou?"
 
-　　“不知道，不过市舶司应该在那里。”
+"I don't know, but the Office of Maritime Trade should be there."
 
-　　“这倒是，我们奇装异服，口音古怪。广州不是地广人稀的地方。我们又没有勘合路引……”
+"That's true. Our clothes are strange, and our accents are weird. Guangzhou is not a sparsely populated place. And we don't have travel permits or passes..."
 
-　　“不会给充军到辽东吧。”
+"We won't be exiled to Liaodong, will we?"
 
-　　“那倒不至于，不过要是因为奇装异服，举止可疑给拉到衙门里过堂，不死也得脱层皮。”[萧子山][y001]想起看过一些明代来华葡萄牙人的回忆录。有个倒霉的葡萄牙海盗翔实的记载了其被俘后的全过程。虽然他对明代的司法大加赞赏，认为是公正、公平、公开的完美制度，但是又毫不犹豫的说对犯人来说是残酷的。
+"That's unlikely, but if we get dragged to the yamen for a hearing because of our strange clothes and suspicious behavior, we'll be skinned alive even if we don't die." [Xiao Zishan][y001] remembered reading the memoirs of some Portuguese who came to China in the Ming Dynasty. An unlucky Portuguese pirate had recorded in detail the entire process after his capture. Although he greatly praised the Ming Dynasty's justice system, considering it a perfect system of fairness, impartiality, and openness, he also said without hesitation that it was cruel to the prisoners.
 
-　　想到那葡萄牙佬受过的和看到的种种酷刑，[萧子山][y001]不由得打了个冷战，心生畏惧。
+Thinking of the various tortures that Portuguese man had suffered and witnessed, [Xiao Zishan][y001] couldn't help but shiver, a sense of fear rising in his heart.
 
-　　“要不我们找几个汉服网站？我看有几个考据明代服制还是很精心的。”
+"How about we find some Hanfu websites? I've seen a few that are very meticulous in their research of Ming Dynasty clothing."
 
-　　“衣服可以，言行举止学不了。”[王洛宾][y003]反对，“更可疑了。”
+"The clothes might work, but we can't learn the mannerisms and behavior," [Wang Luobin][y003] objected. "That would be even more suspicious."
 
-　　“要是冒充外国商人——我们可以自称勃泥来的海商。”[文德嗣][y002]提出了新的建议，“也许可以冒充贡使？皇帝不都喜欢万国来朝。”
+"What if we pose as foreign merchants—we could claim to be sea merchants from Borneo." [Wen Desi][y002] proposed a new idea. "Maybe we could pose as tribute envoys? Don't emperors all like to have all nations come to court?"
 
-　　“朝贡贸易那会早停了。何况这会朝廷大概焦头烂额，没啥兴趣。”[萧子山][y001]想了想，“我记得明代对外国人管理很严格，除了葡萄牙人外国商人只能到澳门贸易，船只不能进入珠江。”
+"The tribute trade stopped long ago. Besides, the court is probably overwhelmed with problems right now and has no interest." [Xiao Zishan][y001] thought for a moment. "I remember that the Ming Dynasty had very strict management of foreigners. Except for the Portuguese, foreign merchants could only trade in Macau, and their ships were not allowed to enter the Pearl River."
 
-　　“葡萄牙人能进广州？”
+"The Portuguese can enter Guangzhou?"
 
-　　“对，貌似当年广州每年都会举办交易会，各地的客商都会带着货物去和葡萄牙人交易。”
+"Yes, it seems that Guangzhou held a trade fair every year back then, and merchants from all over would bring their goods to trade with the Portuguese."
 
-　　“原来广交会的历史这么悠久了。”[王洛宾][y003]赞叹了一声。
+"So the Canton Fair has such a long history," [Wang Luobin][y003] exclaimed in admiration.
 
-　　曾经是中国外贸主要窗口的广交会，在明代就有了其前身，不过当时只对葡萄牙商人开放。每年夏天冬天各举行一次，地点就在海珠岛，即现在海珠区总工会一带。
+The Canton Fair, which was once China's main window for foreign trade, had its predecessor in the Ming Dynasty, but at that time it was only open to Portuguese merchants. It was held once each summer and winter at Haizhu Island, which is now the area of the Haizhu District General Labor Union.
 
-　　“可我们谁也不像外国友人，那年头不知道有没有外籍华人？”
+"But none of us look like foreign friends. I wonder if there were any ethnic Chinese with foreign nationality back then?"
 
-　　“也许有吧，谁知道。”
+"Maybe there were, who knows."
 
-　　“伤脑筋，看来得查查史料了。”
+"This is a headache. It seems we have to check the historical records."
 
-　　忽然[萧子山][y001]拍了一下桌子，笑了起来了：
+Suddenly, [Xiao Zishan][y001] slapped the table and laughed:
 
-　　“我们真傻！干吗总想着怎么进广州，我们不就在广州城里？”
+"We're so stupid! Why are we always thinking about how to get *into* Guangzhou? We're already *in* Guangzhou!"
 
-　　众人眼睛一亮。的确，既然虫洞在两个时空的出入地点都是一致的，只要在广州明代城市的范围之内穿越，不就直接进入广州城了吗？至于真发生什么危机，直接打开虫洞逃回来就是了。
+Everyone's eyes lit up. Indeed, since the entry and exit points of the wormhole were the same in both spacetimes, as long as they crossed over within the boundaries of the Ming Dynasty city of Guangzhou, wouldn't they enter Guangzhou city directly? And if any crisis really occurred, they could just open the wormhole and escape back.
 
-　　选择的穿越地点是濠畔街，原在广州城之南的沿江地带，此地早在南宋就是商业发达地区，明初的商业更加繁荣，嘉靖年间增筑新城，就把这个珠江边的商业区也包括进去。至此，广州的南城城墙就直接矗立在珠江畔了。
+The chosen crossing point was Haopan Street, which was originally in the riverside area south of Guangzhou city. This place was already a prosperous commercial area as early as the Southern Song Dynasty. In the early Ming Dynasty, its commerce became even more prosperous. During the Jiajing reign, a new city was built, and this commercial area by the Pearl River was also included. From then on, the southern city wall of Guangzhou stood directly on the bank of the Pearl River.
 
-　　濠畔街在明代就是所谓外省富商云集居住的地方，实际也是走私商人的集中地。这些人与当时珠江口游鱼洲上的渔民勾结，专门贩运“番舶”上的货物，干得是走私贩私的活计。“每番船一到，则通同濠畔街外省富商搬瓷器、丝绵、私钱、火药，满载而去，满载而还。”[萧子山][y001]很怀疑这些所谓的“外省富商”都是一些有官面背景的人物，所以走私贩私才能如此猖獗。
+In the Ming Dynasty, Haopan Street was the so-called gathering place for wealthy merchants from other provinces, and it was actually also a concentration point for smugglers. These people colluded with the fishermen on Youyu Island at the mouth of the Pearl River, specializing in trafficking goods from "foreign ships," engaging in the business of smuggling. "Every time a foreign ship arrived, they would collude with the wealthy merchants from other provinces on Haopan Street to move porcelain, silk floss, private money, and gunpowder, leaving fully loaded and returning fully loaded." [Xiao Zishan][y001] strongly suspected that these so-called "wealthy merchants from other provinces" were all figures with official backgrounds, which was why smuggling could be so rampant.
 
-　　既然都是搞走私的，肯定不会在乎他们到底是哪来的。利润是商人的本性。从这点来说，濠畔街的商人似乎是最适合接触的。
+Since they were all smugglers, they certainly wouldn't care where they came from. Profit is the nature of a merchant. From this point of view, the merchants of Haopan Street seemed to be the most suitable people to contact.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
