--- a/_posts/2009-9-20-1-02000.md
+++ b/_posts/2009-9-20-1-02000.md
@@ -1,86 +1,87 @@
 ---
 layout: post
-title: 第二十节 北美分舵
+title: "Section 20: The North American Branch"
 category: 1
 path: 2009-9-20-1-02000.md
 tag: [normal]
 ---
 
-　　随着“第一次机构体制会议”的结束，穿越计划终于进入到实质性准备的阶段。这些专业小组分工负责筹备本专业方向的计划、预案和采购清单。被通知来报到的人员也逐渐增多。
+With the conclusion of the "First Institutional Framework Meeting," the transmigration plan finally entered the substantive preparation stage. These professional groups were assigned to prepare plans, proposals, and procurement lists for their respective professional fields. The number of people notified to report for duty also gradually increased.
 
-　　每个到来的人员，在登记之后，都必须接受为期30天的全天基本军事训练，训练内容包括队列、土工作业、越障、格斗和基本生存技能。
+Every person who arrived, after registration, had to undergo a 30-day full-time basic military training. The training content included drill, earthwork, obstacle courses, combat, and basic survival skills.
 
-　　训练随后，按其能力所长和有意从事的行业，由总务组安排，或者调入各专业组进行策划准备工作，或者进行相关的培训学习——重点培养动手能力。[展无涯][y004]的小机械厂现在基本成了一个技工学校，堆满了报废的零件。根据各专业组的建议，另外选送一些人由穿越公司出钱，去职业培训学校进行相关的短期技能培训。
+After the training, based on their abilities and intended profession, they were arranged by the General Affairs Group to either be transferred to various professional groups for planning and preparation work, or to undergo relevant training and learning—with a focus on developing practical skills. [Zhan Wuya][y004]'s small machinery factory had now basically become a technical school, piled high with scrapped parts. Based on the suggestions of the various professional groups, some people were also selected to be sent by the Transmigration Company to vocational training schools for short-term skills training.
 
-　　从前的IT精英，现在在学习砌墙铺瓦；从前的办公室文员，此时在学踩缝纫机；更多从来就没进过车间的人，却围绕着机床或者工作台，笨拙的学习着手艺。
+Former IT elites were now learning to lay bricks and tiles; former office clerks were now learning to operate sewing machines; and many more who had never set foot in a workshop were now clumsily learning a trade around machine tools or workbenches.
 
-　　原来就从事技术性工作的穿越众们，除了忙于每天的文件和会议，还不得不承担起培训的责任。
+The transmigrators who were originally engaged in technical work, in addition to being busy with daily documents and meetings, also had to take on the responsibility of training.
 
-　　[吴南海][y009]的责任更大，他负责把一群从没下过田的人教育成农业科技工作者。虽然某些穿越者家庭也是农村出身，但是下地干过农活的人基本上是没有的。能分辨麦苗和韭菜的已经很好了。
+[Wu Nanhai][y009]'s responsibility was even greater. He was responsible for educating a group of people who had never been in a field into agricultural science and technology workers. Although some transmigrator families were also from rural backgrounds, there were basically no one who had actually worked on a farm. Being able to distinguish between wheat seedlings and chives was already very good.
 
-　　有一点雷打不动，就是所有在基地生活的人，无论从事什么工作，每天早晨都必须进行长跑锻炼，以强壮体魄。正如[文总][y002]指示的那样：“打不过，起码也得跑得过土人”。
+One thing was set in stone: everyone living at the base, regardless of their work, had to participate in long-distance running every morning to strengthen their physique. As [Chief Wen][y002] had instructed: "If you can't beat them, you at least have to be able to outrun the natives."
 
-　　体育组还搞了不少军体游戏，每天晚饭后进行，作为锻炼身体和反应能力的重要手段。
+The Sports Group also organized many military sports games, which were held every evening after dinner, as an important means of exercising the body and reaction skills.
 
-　　不是每个人都会来，来的也不会都留下。有人迟疑了、反悔了——毕竟这个社会对多数人还是有太多的可留恋之处，把自己投身到那异空间的世界里，去博取不可知道的未来，是需要极大的勇气的。另外有些人，认为穿越是一种摆脱社会约束为所欲为的机会，现在要面对长期的训练培训，还要受到严格的作息制度和各种规章的约束，感到不耐烦，坚持不了几天就走人了。
+Not everyone who came would come, and not everyone who came would stay. Some hesitated, some backed out—after all, this society still had too many things for most people to be attached to. To throw oneself into that other world of time and space, to gamble for an unknown future, required great courage. In addition, some people thought that transmigration was an opportunity to escape social constraints and do whatever they wanted. Now they had to face long-term training, and were also subject to a strict schedule and various rules and regulations. They became impatient and left after a few days.
 
-　　留下来得人，继续着他们的工作。受到将要篡改历史这一前所未有的冒险的狂热情绪所影响，这群人几乎不眠不休的起草着各式各样的计划和方案。每天晚上[萧子山][y001]走过走廊的时候，都可以听到各个办公室里的吼叫、争论和敲打键盘的声音。总务组每天都得散发许多茶叶和咖啡——不提供香烟，这是奢侈品。
+The people who stayed continued their work. Influenced by the feverish excitement of the unprecedented adventure of tampering with history, this group of people drafted all kinds of plans and proposals almost without sleep. Every night when [Xiao Zishan][y001] walked down the corridor, he could hear the shouting, arguing, and keyboard tapping from the various offices. The General Affairs Group had to distribute a lot of tea and coffee every day—cigarettes were not provided, as they were a luxury.
 
-　　大量的组织和协调工作对穿越者的组织管理能力提出了极大的挑战，如果这不是一个为了另一个时空而组织起来的群体，初期表现出来的混乱状况足以让它的财政损失惨重。当[萧子山][y001]把一个个红包上交给财务股的时候，虽然知道这些钱对他不再有什么意义还是觉得十分肉疼……他啥时候拿过这么多的红包啊。
+The large amount of organizational and coordination work posed a great challenge to the organizational and management capabilities of the transmigrators. If this were not a group organized for another time and space, the chaotic situation in the initial stage would have been enough to cause it heavy financial losses. When [Xiao Zishan][y001] handed over one red envelope after another to the finance department, although he knew that this money would no longer have any meaning to him, he still felt a great pain in his heart... When had he ever received so many red envelopes?
 
-　　执委会当时并没有意识到自己参与组织了一个多么复杂的系统工程。准备工作中涉及到的物品有成千上万种，许多只有专业人士才知道它有多么重要的作用。现代工业体系的庞杂系统，让每天都过手许多采购清单的[萧子山][y001]惊叹不已。
+The Executive Committee did not realize at the time what a complex system engineering project they were involved in organizing. There were thousands of items involved in the preparation work, many of which only professionals knew how important they were. The complex system of the modern industrial system amazed [Xiao Zishan][y001], who handled many procurement lists every day.
 
-　　幸好IT组为整个系统架设了一套OA系统，这套设置了不同权限的OA系统使得执委会能够清楚地知道人员状况，工作进度，物品储备情况和各种方案。[文德嗣][y002]的办公桌上终于不再有大堆的文件了。
+Fortunately, the IT group set up an OA system for the entire system. This OA system, with different permissions set, allowed the Executive Committee to clearly know the personnel situation, work progress, material reserves, and various plans. [Wen Desi][y002]'s desk was finally no longer piled high with documents.
 
-　　每一个项目的准备工作进展都很顺利，唯一没有变化的进展就是体育器械。一直保留在原有的状态下。
+The preparation work for every project was progressing smoothly. The only thing that remained unchanged was the sports equipment. It had been kept in its original state.
 
-　　所谓体育器械和那掩人耳目的体育组的性质是一回事，实际就是代指武器，尤其是枪支。刀具，虽然属于管制物品，能正常获得的渠道还是不少的，通过网络，能买到各式各样的刀具：从[文总][y002]自己不惜重金自己花3万买来的柄长80公分，刃长120公分的明代倭样北方边军式折叠钢步兵长刀，五六把那著名的三棱枪刺，到日军剑形军刺，欧美的M9、D80……简直应有尽有。关于选什么样的刀具，还引发了多次激烈的争论。但是枪的问题，满腹经纶，数据张嘴就来的人不少，真真正正搞到枪的人却是没有。
+The so-called sports equipment was of the same nature as the deceptive Sports Group. It was actually a code name for weapons, especially firearms. Knives, although they were controlled items, could still be obtained through many normal channels. Through the internet, one could buy all kinds of knives: from the Ming Dynasty Japanese-style northern border army folding steel infantry longsword that [Chief Wen][y002] himself had spent a fortune of 30,000 yuan on, with a handle length of 80 cm and a blade length of 120 cm, to five or six of the famous three-edged bayonets, to Japanese sword-style bayonets, and European and American M9s, D80s... there was almost everything. There were also many heated debates about what kind of knife to choose. But on the issue of guns, there were many people who were full of knowledge and could spout data off the top of their heads, but there was no one who could actually get a gun.
 
-　　不过世界上总有金手指，正如穿越者总能被雷劈一样。
+But there are always golden fingers in the world, just as transmigrators are always struck by lightning.
 
-　　这天，在[文总][y002]的办公室里来迎来了一位神秘的来客。
+On this day, a mysterious visitor came to [Chief Wen][y002]'s office.
 
-　　好吧，这话其实不确切，来人其实是一个年近四十的男人，平淡无奇的很，类似知识分子的模样，穿着简单但是很考究。席亚洲被叫进办公室的时候，他正在和[文德嗣][y002]说什么，周围几个执委会的委员都是一脸兴奋。
+Well, that's not entirely accurate. The visitor was actually a man in his late thirties, very ordinary, looking like an intellectual, dressed simply but elegantly. When Xi Yazhou was called into the office, he was talking to [Wen Desi][y002] about something, and the several Executive Committee members around them were all looking excited.
 
-　　“难道是军火贩子？”席亚洲的警惕性忽然上来了，最近执委会讨论最多的就是搞武器的事情。难道他们自己找来了这么个人物。太猛浪了！这行的人物不好招惹啊。他不由对[文总][y002]的轻率感到有些恼怒。
+"Could he be an arms dealer?" Xi Yazhou's vigilance suddenly rose. Recently, the most discussed topic in the Executive Committee was the matter of acquiring weapons. Could they have found such a person themselves? Too reckless! People in this line of work are not to be trifled with. He couldn't help but feel a little annoyed at [Chief Wen][y002]'s rashness.
 
-　　“我给你们介绍一下，”[文德嗣][y002]注意到了席亚洲的神情变化，“这位是时袅仁。一位医生。”
+"Let me introduce you," [Wen Desi][y002] noticed the change in Xi Yazhou's expression. "This is Shi Niaoren. A doctor."
 
-　　“时大夫您好。我是席亚洲。”
+"Dr. Shi, hello. I am Xi Yazhou."
 
-　　“幸会！”时袅仁握了手，“我们马上就是战友了。”说罢哈哈大笑起来。
+"A pleasure!" Shi Niaoren shook his hand. "We will be comrades-in-arms soon." After saying that, he burst into laughter.
 
-　　“时大夫是从美国特意回来参加我们的行动的。”[文德嗣][y002]解释道，“他可是北美分舵的舵把子。”
+"Dr. Shi came back from the United States specifically to participate in our operation," [Wen Desi][y002] explained. "He is the helmsman of the North American Branch."
 
-　　“可不敢这么说。”时袅仁挥了下手，“我们这次在北美一共有四个人，下了决心参加穿越行动。小瑞把房子都给卖了，准备给大家买枪！”
+"I wouldn't dare say that," Shi Niaoren waved his hand. "There are four of us in North America this time who have made up our minds to participate in the transmigration. Little Rui even sold his house to buy guns for everyone!"
 
-　　“买枪！”这个词让席亚洲打了个激凌。他本来对搞枪的事情并不太热衷，因为知道希望不大。最多通过网络渠道能高价再搞一些五连发来。现在居然有人能直接买到现代化的枪支——这对穿越众的战力提高可不是一个台阶的问题，而是飞跃啊。
+"Buy guns!" This word sent a shiver down Xi Yazhou's spine. He had not been very enthusiastic about getting guns because he knew there was little hope. At most, they could get some more five-shot pump-actions at a high price through online channels. Now, someone could directly buy modern firearms—this was not just a step up for the transmigrators' combat power, but a leap.
 
-　　“对，买枪。”时袅仁实际是个传染病学的大夫，因为也长期泡网，所以知道了这次行动。这次单独回国，就是知道了穿越者武器匮乏的问题，特意来商议。
+"Yes, buy guns." Shi Niaoren was actually an infectious disease doctor. Because he also spent a lot of time online, he learned about this operation. He came back to the country alone this time precisely because he knew about the transmigrators' lack of weapons and came specifically to discuss it.
 
-　　“说说吧。买什么枪呢？”
+"Tell us about it. What kind of guns are we buying?"
 
-　　“当然是五六半了，价格便宜，量又足。”时袅仁介绍说SKS系列的半自动步枪在美国虽然已经涨价了不少，还是相对比较便宜的武器：南斯拉夫的还不到300美元，北方的400美元。枪店里货足够，有钱买的话，想买多少买多少。
+"Of course, it's the Type 56 carbine. The price is cheap, and the quantity is sufficient." Shi Niaoren explained that although the price of SKS series semi-automatic rifles in the United States had risen a lot, they were still relatively cheap weapons: the Yugoslavian ones were less than $300, and the Norinco ones were $400. There were enough in the gun stores. If you had the money, you could buy as many as you wanted.
 
-　　“能买AK吗？机关枪呢？”[王洛宾][y003]兴致勃发起来。
+"Can we buy AKs? What about machine guns?" [Wang Luobin][y003] became excited.
 
-　　“AK的半自动可以买，自动武器没戏。”时袅仁有点遗憾。
+"Semi-automatic AKs can be bought, but automatic weapons are out of the question." Shi Niaoren was a little regretful.
 
-　　“不会吧？有的州会松一点么？美国合法持有自动武器的人也不少。”
+"No way? Are some states more lenient? There are quite a few people in the United States who legally own automatic weapons."
 
-　　“对，买自动武器要有三级照，还要每年缴税。这倒问题不大——有的州比较宽松想搞没问题的。问题是这类自动武器必须是1987年以前就在市场上销售的。这是受1986年通过的Firearms Owners` Protection Act法案的限制。所以现在的自动武器不但价格奇高，而且普遍枪龄老，状况比较差。”
+"Yes, to buy automatic weapons, you need a Class 3 license and have to pay an annual tax. That's not a big problem—some states are more lenient, so it's not a problem if you want to get one. The problem is that this type of automatic weapon must have been on the market before 1987. This is restricted by the Firearms Owners' Protection Act passed in 1986. So now, automatic weapons are not only ridiculously expensive, but they are also generally old and in poor condition."
 
-　　“这样……”大家有点失望。对他们来说，似乎机关枪才是最最保险的大杀器。
+"Is that so..." Everyone was a little disappointed. To them, it seemed that machine guns were the most reliable ultimate weapon.
 
-　　“没关系，有半自动武器也很厉害了。”席亚洲显然并不太在乎全自动还是半自动。
+"It's okay, having semi-automatic weapons is also very powerful." Xi Yazhou was obviously not too concerned about whether they were fully automatic or semi-automatic.
 
-　　“我们现在就是想请示一下执委会，到底买什么枪比较好。”时袅仁有点尴尬，“实际上我不玩枪的，小瑞虽然比较熟悉，也不算专业。这里有军人、有资深爱好者，应该会更清楚我们的需求吧。”
+"We just want to ask the Executive Committee for instructions on what kind of gun is better to buy." Shi Niaoren was a little embarrassed. "Actually, I don't play with guns. Although Little Rui is more familiar, he is not a professional. There are soldiers and senior enthusiasts here, so you should know our needs better."
 
-　　“那就五六半吧，”[王洛宾][y003]有点失望地说道，“这里多数人军训的时候都打过，也分解过。算是比较熟悉的武器。”
+"Then let's go with the Type 56 carbine," [Wang Luobin][y003] said with some disappointment. "Most of the people here have fired it during military training and have also disassembled it. It's a relatively familiar weapon."
 
-　　“不，我倒不这样看。五六半不是一个好的选择。”
+"No, I don't see it that way. The Type 56 carbine is not a good choice."
 
-　　说这话的人，却是部队出身，理论上对五六半有着深厚感情的席亚洲。
+The person who said this was Xi Yazhou, who came from a military background and theoretically should have a deep affection for the Type 56 carbine.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
