--- a/_posts/2009-9-21-1-02100.md
+++ b/_posts/2009-9-21-1-02100.md
@@ -1,98 +1,94 @@
 ---
 layout: post
-title: 第二十一节 武器问题
+title: "Section 21: The Weapons Problem"
 category: 1
 path: 2009-9-21-1-02100.md
 tag: [normal]
 ---
 
-　　“选择什么样的武器，首先要看我们身处的环境和面对的敌人。”席亚洲停顿了一下，大概为了组织语言，“我们的主要对手有三个：以大量简易火器＋冷兵器混装步兵为主力的汉人武装，代表是明朝军队，也包括包括李闯之类的明末流寇，他们的主力基本来自明军的叛卒逃兵，装备战法基本都一样；以骑兵为主力，配置有少量火器的满清军队；以各种火器为主的在中国沿海极其活跃的中外海盗。
+"The choice of what kind of weapon to use depends first on the environment we are in and the enemies we face." Xi Yazhou paused for a moment, probably to organize his thoughts. "We have three main opponents: Han Chinese armed forces, which are mainly composed of infantry with a large number of simple firearms mixed with cold weapons, represented by the Ming army, and also including late Ming roving bandits like Li Zicheng. Their main forces basically come from the rebellious soldiers and deserters of the Ming army, and their equipment and tactics are basically the same; the Manchu Qing army, which is mainly composed of cavalry and equipped with a small number of firearms; and the various Chinese and foreign pirates who are extremely active along the coast of China, mainly using various firearms.
 
-　　“我们不但人数偏少，而且基本都是没有实战经验的人，在心理素质上未必有这些古人强，所以我们的武器要坚持二点：
+"Not only are we few in number, but we are also basically people with no actual combat experience. In terms of psychological quality, we may not be as strong as these ancients. Therefore, our weapons must adhere to two points:
 
-　　“足够大的射程，在尽量远的射程上就能开火压制敌人冲锋，也可以用来打击敌人的火炮炮手、指挥官。拿破仑战争时期的8磅和12磅野战火炮，有效射程不过900米，17世纪的水平更低，估计最多有400米。步枪至少应该有这个射程。
+"A sufficiently long range, so that we can open fire to suppress the enemy's charge at the farthest possible range, and also be used to strike the enemy's artillery gunners and commanders. The 8-pounder and 12-pounder field guns of the Napoleonic era had an effective range of only 900 meters. The level of the 17th century was even lower, estimated to be at most 400 meters. The rifle should at least have this range.
 
-　　“我们的前二个对手在作战中都会以骑兵作为突击力量，所以武器得有瞬间大量投射弹药的能力才能压制骑兵的冲击。最好是用机枪了，不过暂时看来不可能。刚才听了介绍，北美分舵恐怕也没法搞来机枪或者自动步枪。”
+"Our first two opponents will both use cavalry as a shock force in combat, so our weapons must have the ability to project a large amount of ammunition in an instant to suppress the impact of the cavalry. It would be best to use machine guns, but for now, it seems impossible. After listening to the introduction just now, I'm afraid the North American branch can't get machine guns or automatic rifles either."
 
-　　“那为何SKS不符合呢？我看都符合么：400米有效射程，10发弹仓，最大射速每分钟40发。性能不算出众，好在构造简单，大家基本又都摸过。”
+"Then why doesn't the SKS meet the requirements? I think it meets them all: 400-meter effective range, 10-round magazine, maximum rate of fire of 40 rounds per minute. The performance is not outstanding, but the good thing is that its structure is simple, and everyone has basically handled it before."
 
-　　“我对7.62*39的M43弹没好感，”席亚洲嘿嘿地笑了笑，“这种步枪弹用的是腐蚀性底火，对身管腐蚀性很大，要经常擦拭保养。海南这个地方本身就环境恶劣，这里多数人即没有从军经验，又对枪支不了解，很可能因为不勤擦枪而让枪锈成一块。没多久就报废了。”
+"I don't have a good feeling about the 7.62x39mm M43 cartridge," Xi Yazhou chuckled. "This rifle cartridge uses a corrosive primer, which is very corrosive to the barrel and requires frequent wiping and maintenance. The environment in Hainan is harsh in itself. Most of the people here have no military experience and don't know much about firearms. It's very likely that they will let their guns rust into a block because they don't clean them often. They will be scrapped in no time."
 
-　　“连枪都不擦的废柴，还能当兵么？这理由太站不住脚了吧。”
+"Can a good-for-nothing who doesn't even clean his gun still be a soldier? This reason is too weak, isn't it?"
 
-　　席亚洲不理会反对的声音：“腐蚀性底火对弹壳也有很强的腐蚀性。对子弹复装有很大影响。”
+Xi Yazhou ignored the dissenting voice: "Corrosive primers are also very corrosive to the cartridge case. This has a great impact on reloading ammunition."
 
-　　“这倒是要考虑一下。复装子弹是我们早期唯一补充弹药的方法。”
+"That is something to consider. Reloading ammunition is our only way to replenish ammunition in the early stages."
 
-　　“华约系统的武器，是以好用够用为出发点的。换句话说，有能力把武器做得更好，但是它首先考虑的是成本问题，从这个角度来说，一支经久耐用，但是消耗过多资源不符合他们的军事原则。”
+"The weapons of the Warsaw Pact system are based on the principle of being easy to use and sufficient. In other words, they have the ability to make the weapons better, but they first consider the cost issue. From this perspective, a durable weapon that consumes too many resources does not conform to their military principles."
 
-　　“在本时空，当然没关系，枪坏了换一支就是，而我们没有途径去补充新的现代武器，所以武器的全使用寿命就必须考虑。”
+"In this time and space, of course, it doesn't matter. If a gun breaks, just replace it. But we have no way to supplement new modern weapons, so the full service life of the weapon must be considered."
 
-　　“你的意思是说SKS的使用寿命太短么？”
+"Are you saying that the service life of the SKS is too short?"
 
-　　“不错，不仅是SKS，也包括包括AK这类武器。”他舒展了一下坐麻的腿脚，“另外，SKS是一种标准的半自动步枪。是标准的半自动。”席亚洲着重说了这个字眼，“也就是说，它不能变成自动步枪。”
+"That's right, not only the SKS, but also weapons like the AK." He stretched his numb legs and feet. "In addition, the SKS is a standard semi-automatic rifle. It is a standard semi-automatic." Xi Yazhou emphasized this word. "That is to say, it cannot be converted into an automatic rifle."
 
-　　会场上的人愣了一下，忽然明白过来了，原来对他的发言不以为然的人也展开了眉头。
+The people in the meeting were stunned for a moment, then suddenly understood. Even those who had been dismissive of his speech now relaxed their brows.
 
-　　没错，美国民用枪支市场上是没有自动武器的，但是那些以军用自动步枪为蓝本制造来的民用AK\AR的半自动步枪，其实都能改装成全自动武器。当然美国法律是严禁这样做得，触犯者是重罪。但是FBI管不到大明啊！
+That's right, there are no automatic weapons on the US civilian gun market, but those semi-automatic rifles based on military automatic rifles, such as the civilian AK/AR, can actually be converted into fully automatic weapons. Of course, US law strictly prohibits this, and offenders are guilty of a felony. But the FBI has no jurisdiction in the Great Ming!
 
-　　AK47啊，M－16啊，这些大家熟悉得不能再熟悉的字眼顿时在会议室里飞舞，每个人都幻想着自己挥舞一支AK或者M16的英姿。
+AK-47, M-16, these words that everyone was all too familiar with suddenly flew around the conference room. Everyone fantasized about the heroic posture of themselves wielding an AK or an M-16.
 
-　　“那就大批买入民用AK吧！”时袅仁也兴奋起来了，“这枪2004年之后上市很多，货挺足的，我们的机械能力，改枪不成问题。”
+"Then let's buy a large number of civilian AKs!" Shi Niaoren also became excited. "There have been many of these guns on the market since 2004, and the stock is quite sufficient. With our mechanical capabilities, converting the guns is not a problem."
 
-　　“为什么要AK，我要M16！”
+"Why an AK? I want an M-16!"
 
-　　“你懂什么，那叫AR15。”
+"What do you know, that's called an AR-15."
 
-　　“改了不就成M16了。”
+"If you convert it, won't it become an M-16?"
 
-　　“呵呵，我还是那话：不看好M43弹。”席亚洲很满意自己这番话的效果，“同样我也不建议用M16之类的小口径步枪。不仅是停止作用的问题，还涉及到最大射程上的威力。另外小口径步枪弹对生产技术要求也高一些。我推荐使用7.62mm北约弹的半自动步枪。如M－14、FN－FAL这类步枪的民用版。直接改成自动步枪也就没必要很迫切的装备机枪了。”
+"Hehe, I still say the same thing: I'm not optimistic about the M43 cartridge." Xi Yazhou was very satisfied with the effect of his words. "Similarly, I don't recommend using small-caliber rifles like the M-16. It's not just a matter of stopping power, but also involves the power at maximum range. In addition, small-caliber rifle ammunition also has higher production technology requirements. I recommend using a semi-automatic rifle that uses the 7.62mm NATO round, such as the civilian versions of rifles like the M-14 and FN-FAL. If we convert them directly into automatic rifles, there will be no urgent need to equip machine guns."
 
-　　“M－14？听说精度很不错，就是威力过剩，而且重量也大。”
+"M-14? I heard the accuracy is very good, but the power is excessive, and it's also heavy."
 
-　　“这枪是不是复杂了点？貌似美国人的枪都是结构复杂，保养困难。”
+"Isn't this gun a bit complicated? It seems that American guns are all complex in structure and difficult to maintain."
 
-　　枪支的争议持续了半个小时，把时袅仁闷坏了，眼看这样的争论没什么结果，他就提议直接在网络上和小瑞谈谈，毕竟小瑞对美国的枪市比较了解，对民用枪里的古怪东西看得也多，不像国内打死了也就知道个AR15是M16半自动民版。
+The dispute over firearms lasted for half an hour, which bored Shi Niaoren. Seeing that such a debate would have no result, he proposed to talk directly to Little Rui on the internet. After all, Little Rui was more familiar with the US gun market and had seen more strange things in civilian guns, unlike people in China who at most knew that the AR-15 was the semi-automatic civilian version of the M-16.
 
-　　结果小瑞在网上提出了另外一种枪：谁也没听说过的Saiga－308步枪。这是一种使用7.62mmNATO弹的俄制民用半自动步枪。
+As a result, Little Rui proposed another type of gun on the internet: the Saiga-308 rifle, which no one had ever heard of. This was a Russian-made civilian semi-automatic rifle that used the 7.62mm NATO round.
 
-　　能打5.56子弹的AK不稀罕，连北方工业都出口过用5.56弹的五六冲。但是这种AK血统的半自动步枪却是一种使用美帝全威力步枪弹的武器。这就比较少见了。
+An AK that can fire 5.56mm bullets is not uncommon. Even Norinco has exported a Type 56 that uses 5.56mm ammunition. But this kind of semi-automatic rifle with an AK pedigree that uses the full-power rifle cartridge of the American empire is relatively rare.
 
-　　Saiga－308是卡拉什尼科夫枪械的主要制造企业伊热夫斯克的工厂专门为国际上AK步枪爱好者而开发的民用运动和狩猎型步枪。在外观上它几乎保留了所有AK步枪的特色，内部零件基本来自AKM和AK74。膛口采用了专为SVDS狙击步枪设计的膛口消焰器，侧面导轨可安装各种苏制、俄制光学瞄准器。Saiga－308有着不错的射击精度：在100m距离上射击10发枪弹，散布圆半径仅40……45mm。武器可靠性也较普通AK更高。针对7.62mm北约弹能量过大的问题，枪托后面装有专门的缓冲垫，效果比较好，第一次打长枪的普通成年男子都没问题。
+The Saiga-308 is a civilian sport and hunting rifle specially developed by the Izhevsk factory, the main manufacturer of Kalashnikov firearms, for AK rifle enthusiasts around the world. In appearance, it retains almost all the features of the AK rifle, and its internal parts are basically from the AKM and AK-74. The muzzle adopts the muzzle flash hider specially designed for the SVDS sniper rifle, and the side rail can be mounted with various Soviet and Russian optical sights. The Saiga-308 has good shooting accuracy: when shooting 10 rounds at a distance of 100m, the dispersion circle radius is only 40-45mm. The reliability of the weapon is also higher than that of an ordinary AK. To address the problem of the excessive energy of the 7.62mm NATO round, a special buffer pad is installed at the back of the stock, which is quite effective. An ordinary adult male shooting a long gun for the first time has no problem.
 
-　　“这枪性能不错，威力足够，有效射程也远。空枪重量3.6kg，标配为8发弹夹，也可以配用20发弹夹和大容量弹鼓。”时袅仁转述着小瑞的提议，“价格不贵，单价500美元，如果大批量购入，还能打点折扣。当然也可以买M1A——就是民版M－14，那就贵多了，市场价格都1000美元以上。”
+"This gun has good performance, sufficient power, and a long effective range. The empty gun weighs 3.6kg. The standard is an 8-round magazine, but it can also be equipped with a 20-round magazine and a large-capacity drum magazine." Shi Niaoren relayed Little Rui's proposal. "The price is not expensive, the unit price is $500. If we buy in large quantities, we can get a discount. Of course, we can also buy the M1A—that is, the civilian version of the M-14, which is much more expensive, with a market price of over $1000."
 
-　　“这么说小瑞建议我们选Saiga－308了？”
+"So Little Rui is suggesting we choose the Saiga-308?"
 
-　　“他可没这么说，”时袅仁是何等人物，早就是滑不留手的职场精英了。这类选武器的事情算是国之大事，选得合适不过是个合理化建议，要是选得不好日后出了麻烦，错误就都是你的了，就算领导能谅解，群众也不会理解。“就是给大家一个建议。具体怎么决定，还是看执委会。”
+"He didn't say that," Shi Niaoren was a shrewd person, a slippery workplace elite. This kind of matter of choosing weapons was a major national affair. If the choice was appropriate, it was just a reasonable suggestion. If the choice was bad and caused trouble later, the mistake would be all yours. Even if the leadership could forgive you, the masses would not understand. "It's just a suggestion for everyone. The specific decision still depends on the Executive Committee."
 
-　　这等于把皮球又踢会执委会了。这边都在议论纷纷，委决不下。与业余人员激情澎湃的讨论相比，体育组除了一个席亚洲之外，根本没人对这个问题感兴趣。在他们看来五六半就足够用了，何必扯出这么多莫名其妙的玩意。
+This was equivalent to kicking the ball back to the Executive Committee. Everyone was discussing animatedly, unable to make a decision. Compared with the passionate discussion of the amateurs, no one in the Sports Group, except for Xi Yazhou, was interested in this issue at all. In their view, the Type 56 carbine was good enough. Why bring up so many inexplicable things?
 
-　　“栓动步枪不行吗？”[文总][y002]想起过去在美国旅游的时候去看过一次枪展，那上面各式各样的古董步枪多如牛毛，毛瑟、春田、莫辛－纳干……应有尽有。而且价格很便宜。这样的步枪配上长长的刺刀，配黑色高帽，红黄色毛呢制服的士兵们排成横列缓步前进，那才叫壮观。
+"Are bolt-action rifles not an option?" [Chief Wen][y002] remembered seeing a gun show when he was traveling in the United States in the past. There were as many antique rifles of all kinds as ox hair: Mausers, Springfields, Mosin-Nagants... everything you could think of. And the prices were very cheap. Such rifles, with long bayonets, and soldiers in black high hats and red and yellow wool uniforms marching slowly in ranks, that would be a magnificent sight.
 
-　　不过他知道要穿越众去干这事情是没可能的，这个小爱好就不提了。
+However, he knew that it was impossible for the transmigrators to do this, so he didn't mention this little hobby.
 
-　　7.62北约弹VS7.62华约弹在这次会议里依然没有任何结果。最后归纳出来六种不同方案：
+The 7.62 NATO vs. 7.62 Warsaw Pact debate still had no result in this meeting. In the end, six different plans were summarized:
 
-　　采用SKS半自动。
+1.  Adopt the SKS semi-automatic.
+2.  Adopt the M1A (M-14) semi-automatic.
+3.  Adopt the Saiga-308.
+4.  Adopt the civilian semi-automatic versions of the AK-47/74 or M-16, to be converted to full-auto later. There were different opinions on whether to choose the AK or the M-16.
+5.  Simultaneously adopt a high-power long-range rifle and an intermediate-power rifle or a small-caliber rifle.
+6.  Adopt a bolt-action rifle.
 
-　　采用M1A（M－14）半自动
+Obviously, each plan had its supporters, and each plan had its pros and cons. Just as the discussion was beginning to turn unfriendly, [Wen Desi][y002] timely shifted the topic to personal self-defense weapons.
 
-　　采用Saiga－308
+The Sports Group had originally prepared daggers as the personal self-defense solution for everyone, but now with the golden finger of the North American Branch, they couldn't help but want to be extravagant. Handguns are very popular in the US civilian market, and there are many models to choose from. However, for the sake of simplifying equipment and facilitating repairs and parts interchangeability, only one type of handgun could be chosen.
 
-　　采用AK47/74或者M16的民用半自动版，以后改全自动的。到底是AK还是M16，又有不同的意见。
+There was no objection to using the 9mm Parabellum round. After all, it was a mainstream handgun ammunition. As for the handgun itself, most people leaned towards the M9—the reason being that it looked cool and was well-known. The heroic image of Brother Mark was unforgettable for this generation. The M1911 also had supporters, but it was slightly heavier and not liked by most of the petty bourgeoisie. As for the PPK, S&W revolvers, and Glocks, they all had their fans.
 
-　　同时采用一种大威力远程步枪和一种中间威力步枪或者小口径步枪。
+For the sake of being easy to use, light, and easy to maintain, the Executive Committee had originally intended to choose the S&W 9mm revolver. It had all the disadvantages of a revolver: gas leakage, short range, low ammunition capacity, and slow reloading. However, from the Executive Committee's point of view, this thing was only for self-defense within twenty or thirty meters anyway, and did not require outstanding performance. The key was to be simple and durable.
 
-　　采用栓动步枪
+The problem was that the Sports Group clearly did not like this weapon. The PLA had never had a tradition of using revolvers, and everyone was not confident enough in this thing. Moreover, the shape of the revolver was obviously not cool enough. The sight of this gun reminded most transmigrators of the under-powered Royal Hong Kong Police. In the end, the compromise was that both the M9 and the S&W M337 were included in the procurement list.
 
-　　显然每一种方案都有支持者，每一种方案都有其优劣。正当讨论开始向不友好的方向发展的时候，[文德嗣][y002]及时的把话题转向了个人自卫武器上。
-
-　　体育组本来为大家准备的个人自卫方案是匕首，但是此时有了北美分舵这个金手指，不免要奢侈一把。手枪在美国民用市场上非常大众化，可选择的型号很多。不过出于简化装备，便于修配和零件互换考虑，只能选择一种手枪。
-
-　　使用9mm巴拉贝鲁姆弹没什么异议，毕竟这是一种主流的手枪弹药，至于手枪本身，多数人倾向M9——原因是它长得帅知名度又高，小马哥的英姿是这一代人难以忘怀的。M1911也有人支持，奈何略重了一些，不讨多数小资的喜欢。至于PPK、S&W左轮、Glock，都有人捧场。
-
-　　出于好用，轻便、易维护多种考虑，执委会本来意愿是选择S&W的9mm左轮手枪，它有左轮手枪的一切不利之处：漏气，射程近，弹药少，装填慢的问题。不过从执委会看来，这东西反正也是在二三十米之内防身用的，无需太出众的性能，关键就是简单耐用。
-
-　　问题是体育组显然不喜欢这种武器，PLA从来没有使用左轮枪的传统，大家对这东西不够放心，而且左轮枪的造型显然不够酷，一看到这枪就让多数穿越众想起了火力贫乏的皇家香港警察。最后平衡的后果就是M9和S&W的M337都列入了采购清单。
 [y002]: /characters/y002 "文德嗣"
