--- a/_posts/2009-9-23-1-02300.md
+++ b/_posts/2009-9-23-1-02300.md
@@ -1,94 +1,95 @@
 ---
 layout: post
-title: 第二十三节 高青的烦恼
+title: "Section 23: Gao Qing's Troubles"
 category: 1
 path: 2009-9-23-1-02300.md
 tag: [normal]
 ---
 
-　　五羊城的春天渐渐地进入尾声，天气却一点不见热。高青坐在院子里，两眼呆呆地望着天。自从成为澳洲老爷们的奴仆，到现在已快二个月了。
+Spring in the City of Five Rams was gradually coming to an end, yet the weather showed no sign of warming. Gao Qing sat in the courtyard, staring blankly at the sky. It had been almost two months since he had become a servant to the Australian masters.
 
-　　当初拨过去的事后，高老爷特意吩咐过他，要他把澳洲老爷们的一举一动都回报过去，还许了诺，若是澳洲老爷们一去不回了，或是出了什么差池，依然把他这一家人都收回去，断然不会叫他们流落街头。
+After he was assigned, Master Gao had specifically instructed him to report back on the Australian masters' every move. He had also promised that if the Australian masters left and never returned, or if something went wrong, he would still take his family back and would certainly not let them become destitute on the streets.
 
-　　他和老婆也商量了几回，万一要是澳洲老爷们要带他们回澳洲又如何。那时不知道能不能求老爷留下他们一家。
+He and his wife had also discussed several times what would happen if the Australian masters wanted to take them back to Australia. At that time, they didn't know if they could beg the masters to let their family stay.
 
-　　这些澳洲老爷，待下人倒是宽厚。知道他家苦难，又额外给月米，又给儿子月钱。可他们终归是外国的海商，总有一天要回去的，若真要把他们带回澳洲去，又当如何呢？按情理来说：这几位老爷是他这一家的主子，主子要去哪里，奴才也得跟着去哪里，天经地义。可他不想再一次的离乡背井——当初从家乡逃荒卖身，已经是离了故土，若要真去了那万里之外的澳洲……那澳洲不用说便是蛮荒之地，即使有些奇巧淫器的物件，又怎么能比得上中华呢？这广州城市虽不是他的家乡，住了这些年，也还是很眷恋的。
+These Australian masters were indeed kind to their servants. Knowing his family's hardship, they gave him extra monthly rice and also gave his son a monthly allowance. But they were, after all, foreign sea merchants and would have to go back one day. If they really wanted to take them back to Australia, what should they do? Logically speaking, these masters were his family's masters. Wherever the master went, the servant had to follow. It was only natural. But he did not want to be uprooted from his home again—he had already left his homeland when he fled the famine and sold himself into servitude. If he really went to that Australia, tens of thousands of li away... that Australia was undoubtedly a barbaric land. Even if they had some strange and ingenious objects, how could it compare to China? Although this city of Guangzhou was not his hometown, he had lived here for these years and was still very attached to it.
 
-　　想来想去，十分的苦恼。他在高老爷家多年，知道佛郎机海商们到了六月便要候着风扬帆而去。澳洲海商多半也是这个时候走吧——会不会要带他们一家走呢？
+Thinking about it over and over, he was extremely troubled. He had been in Master Gao's house for many years and knew that the Frankish sea merchants would set sail with the wind in June. The Australian sea merchants would probably leave around the same time—would they want to take his family with them?
 
-　　他又叹了口气，眯起眼睛来看着后院的门，一会阎管事就要过来了，算起日子来，最近几天便是澳洲老爷们要来得日子。
+He sighed again and squinted at the gate of the backyard. Manager Yan would be coming over soon. Counting the days, the Australian masters were due to arrive in the next few days.
 
-　　这二个月，每隔半个月左右，三位老爷便会来一次，住上好几天。每次他都不知道是什么时候来的，又是怎么进的房子，总是天光大亮的时候，便看到老爷们住的院子门已经打开了，成堆的货物堆放在厅堂和廊檐下。
+In these two months, the three masters would come once every half a month or so and stay for several days. Each time, he never knew when they arrived or how they got into the house. It was always when the sky was bright that he would see the gate of the courtyard where the masters lived was already open, and piles of goods were stacked in the hall and under the eaves.
 
-　　这让他总是觉得很神秘，神秘中又带着些许的恐惧。虽然高老爷或暗示或者明示，又许了他好处，要他把澳洲海商的底细都探出来，他都没敢去做——潜伏到院子里自然不难，万一看到什么不该看得东西……
+This always made him feel very mysterious, and with the mystery came a bit of fear. Although Master Gao had hinted or explicitly stated, and had also promised him benefits, that he should find out the details of the Australian sea merchants, he had never dared to do so—it was not difficult to sneak into the courtyard, but what if he saw something he shouldn't see...
 
-　　高青知道当奴才最要紧的一点就是不该知道的事情一定不要知道。不管老爷是大明的、还是澳洲的。
+Gao Qing knew that the most important thing for a servant was to never know what he was not supposed to know. It didn't matter if the master was from the Great Ming or from Australia.
 
-　　高弟却不了解父亲的心思，一路小跑过来，问：“大，娘问你呢：老爷们什么时候来，她好预备起饭食来。上次王老爷还说要做顿好的，尝尝大明的菜肴。”
+Gao Di, however, did not understand his father's thoughts. He came running over and asked, "Dad, Mom is asking you: when are the masters coming, so she can prepare the meals. Last time, Master Wang even said he wanted to have a good meal and taste the dishes of the Great Ming."
 
-　　“总就这几天吧，日子差不多了。”高举掰着指头算了好半天，“你的账册子都预备好了？”
+"It should be in these few days, the time is about right." Gao Ju counted on his fingers for a long time. "Are your account books all ready?"
 
-　　“都预备好了，上次月底的时候，老爷们都看过，还夸我记得全，细心呢。”高弟有点骄傲扬了扬脖子，“王老爷还帮我改了错白字，那位萧老爷说日后还会教我什么阿拉伯数，算起来比账房先生们还快。”
+"They are all ready. At the end of last month, the masters all looked at them and even praised me for keeping them complete and being meticulous." Gao Di proudly raised his neck. "Master Wang even helped me correct the wrong characters. That Master Xiao said he would teach me something called Arabic numerals in the future, which are even faster for calculation than what the accountants use."
 
-　　“好，好，老爷们喜欢就好。”高青含糊不清地说着。孩子们中老爷的意，本来是好事，若老爷们都是中华人士，倒也算给儿女们找了好去处，可是——唉！他们是外藩人，即使不带他们全家走，只带走一双儿女们中的一二个，他也舍不得。
+"Good, good, as long as the masters like it," Gao Qing said vaguely. It was a good thing that the children were favored by the masters. If the masters were Chinese, it would be a good placement for his children, but—alas! They were foreigners. Even if they didn't take the whole family with them, but only one or two of his children, he would be reluctant to part with them.
 
-　　“我看那[文老爷][y002]很喜欢姐姐，每次都叫姐姐去说话，还赏了姐姐些东西，会不会把姐姐收房？”
+"I think that [Master Wen][y002] likes sister very much. He always calls sister over to talk and has given her some things. Will he take sister as a concubine?"
 
-　　这话重重的打在高青的心上。他沉着个脸，想了半天，才说：“看她的造化了。”心中却并不情愿。
+These words hit Gao Qing's heart heavily. With a sullen face, he thought for a long time before saying, "It depends on her fate." But in his heart, he was not willing.
 
-　　正闷着，却听门响，这是阎管事来了。高青忙迎了上去，请他在院中的石桌旁坐下，又打发儿子去取茶水干果。
+As he was brooding, he heard the gate creak. It was Manager Yan. Gao Qing hurriedly went to greet him, invited him to sit at the stone table in the courtyard, and sent his son to fetch tea and dried fruit.
 
-　　“老高啊，这几天澳洲海商又要来了，老爷吩咐你的事情呢？”阎管事也不客套，开门见山。
+"Old Gao, the Australian sea merchants are coming again in a few days. What about the matter the master instructed you to do?" Manager Yan did not stand on ceremony and got straight to the point.
 
-　　“回您的话，小的实在是探查不明白啊。”高青知道这番话又是免不了的，“那几位老爷，可机警着，从不叫人跟去房里伺候。每次又是总是来无影去无踪的。”
+"Replying to you, sir, I really can't find out anything." Gao Qing knew that this conversation was inevitable. "Those masters are very vigilant and never let anyone follow them into their rooms to serve them. And every time, they come and go without a trace."
 
-　　“都二个月了，掰来掰去还是那么几句话，你真他妈的是个废物。”阎管事一直是高老爷的心腹，从来也没把高青这号连进内院资格都没有粗使奴才放在眼里。开出口也是肆无忌惮。
+"It's been two months, and you're still saying the same few words over and over. You really are a fucking piece of trash." Manager Yan had always been Master Gao's confidant and had never paid any attention to a low-level servant like Gao Qing who didn't even have the qualification to enter the inner courtyard. He spoke without any restraint.
 
-　　“是，是，小的愚钝。”
+"Yes, yes, I am stupid."
 
-　　“你叫我怎么和老爷回话？”阎管事翻起了眼睛，“老爷可是对你很不满啊……”
+"How do you expect me to report back to the master?" Manager Yan rolled his eyes. "The master is very dissatisfied with you..."
 
-　　“那都要请阎管事您多担待，多美言……”高青有点慌了神，在腰里摸了半天，摸出二钱银子来——这是他这二个月结余下来的，准备给二个孩子扯点布置件衣服。此刻阎管事一番半真半假的话，让他害怕了，虽说他已经不是高家的奴才了，但他也并不敢把自己的命运交托在澳洲的老爷们身上。
+"Then I must ask Manager Yan to bear with me, to put in a good word..." Gao Qing panicked a little. He fumbled at his waist for a long time and took out two qian of silver—this was what he had saved up in the past two months, intending to buy some cloth for his two children to make clothes. At this moment, Manager Yan's half-true, half-false words scared him. Although he was no longer a slave of the Gao family, he did not dare to entrust his fate to the Australian masters.
 
-　　阎管事顺手接过来，稍一掂量就塞进了袖子：“老爷那边，我先帮你应付一下。可是这事情，躲得了初一，可躲不过十五，不管怎么的，都得把这几个人的底细给查清了！”
+Manager Yan took it smoothly, weighed it slightly, and stuffed it into his sleeve: "On the master's side, I will help you deal with it for now. But this matter, you can hide from it on the first day, but you can't hide from it on the fifteenth. No matter what, you have to find out the details of these people!"
 
-　　“是、是，小的明白。”
+"Yes, yes, I understand."
 
-　　“海商们一到，便立刻请他们过去。随时。”
+"As soon as the sea merchants arrive, immediately invite them over. At any time."
 
-　　“是，小的知道。”
+"Yes, I know."
 
-　　阎管事说罢扬长而去。高青擦了擦头上的汗，眉头皱得更紧了。帮高老爷探查，终归是要得罪本主的，且不说澳洲老爷们的仁德，他这么做是忘恩负义。单单就是窥探出卖主秘这一层，就是背主之罪，大约不管到哪里都是重罪，就算不死也得脱层皮。若是把高老爷的吩咐置若罔闻，日后想要再投靠就没门了，更不用说高老爷要对付他这么一个奴才，那是不费吹灰之力。
+Manager Yan left after saying that. Gao Qing wiped the sweat from his forehead, his brows furrowed even tighter. To spy for Master Gao would ultimately offend his current masters. Not to mention that the Australian masters were benevolent, his doing so would be an act of ingratitude. Just the act of prying into and selling out his master's secrets was a crime of betraying one's master. It was probably a serious crime no matter where one went. Even if he didn't die, he would be skinned alive. If he ignored Master Gao's instructions, there would be no way to seek refuge with him in the future, not to mention that it would be effortless for Master Gao to deal with a slave like him.
 
-　　正胡思乱想着，却见自己在高家的一个结义兄弟高常过来了，提着个大食盒，都是高老爷送给澳洲老爷们的熏腊小食。高青强打精神，叫自己老婆女儿出来领了，去厨房收拾。
+As he was lost in thought, he saw his sworn brother from the Gao family, Gao Chang, coming over, carrying a large food box filled with smoked and cured snacks that Master Gao had sent for the Australian masters. Gao Qing forced himself to cheer up, called his wife and daughter out to receive it, and went to the kitchen to put it away.
 
-　　“阎管事这厮又来讹兄长了？”高常二十五六的年纪，是个精壮小伙子，他和高青是同乡，也是家乡生活无着逃荒来得广州，托高青作保才卖身到高家来。都在外院打杂使唤，两人即是同乡，又互相照应，便私下结义成了兄弟。
+"Did that scoundrel Manager Yan come to extort you again, brother?" Gao Chang was a strong young man of twenty-five or six. He was from the same hometown as Gao Qing and had also fled to Guangzhou because he couldn't make a living at home. He had sold himself to the Gao family with Gao Qing as his guarantor. They both worked as general servants in the outer courtyard. Since they were from the same hometown and looked out for each other, they had privately become sworn brothers.
 
-　　“唉。”高青倒头哺语。
+"Alas," Gao Qing said, pouring out his troubles.
 
-　　“兄长你也太懦弱了，”高常愤愤不平道，“你如今都是澳洲老爷们的人了，去理他作甚？老爷们仁厚，给你积攒下几个钱，你倒去塞这个狗洞！”
+"Brother, you are too cowardly," Gao Chang said indignantly. "You are now the Australian masters' man. Why do you bother with him? The masters are benevolent and have let you save up a few coins, yet you go and stuff that dog's hole!"
 
-　　“兄弟你就别说了，我是一言难尽啊。”高青望着院墙上的天空，“这一家人……怕日后还是要投靠高老爷。”说罢又不肯多言了。
+"Brother, don't say any more. It's a long story." Gao Qing looked at the sky above the courtyard wall. "This family... I'm afraid we will still have to rely on Master Gao in the future." After saying that, he refused to say more.
 
-　　“奇了，兄长全家的身契都给了澳洲老爷们，为何又要投靠高老爷，难不成老爷们不要你了？”
+"That's strange. The deeds of sale for your whole family have been given to the Australian masters. Why do you want to rely on Master Gao again? Could it be that the masters don't want you anymore?"
 
-　　“那倒没有，老爷们对我们一家，可真没说得。待人宽厚说话又和气。都是好人。”
+"That's not it. The masters have been nothing but good to our family. They are kind and speak gently. They are all good people."
 
-　　“那你想回高家作甚？兄长在高家不过一打杂的奴下之奴罢了。哪比得上现在是半个管事呢。我都羡慕兄长有这样好的运气。”
+"Then why do you want to go back to the Gao family? Brother, in the Gao family, you are just a servant of servants. How can it compare to being half a manager now? I even envy you for having such good luck."
 
-　　“可他们总是外藩的海商啊！”
+"But they are foreign sea merchants after all!"
 
-　　“那又怎么样？又不是红毛绿眼的佛郎机人，毛草草臭哄哄的。”高常不以为然，“老爷们说话虽然听不大明白，穿得又古怪，怎么说也是中华人士呢。”
+"So what? They are not red-haired, green-eyed Franks, who are hairy and smelly." Gao Chang was dismissive. "Although it's hard to understand what the masters are saying, and their clothes are strange, they are still Chinese people after all."
 
-　　“他们总有一天要走得吧，万一要带这一家人走呢？”
+"They will have to leave one day, right? What if they want to take the whole family with them?"
 
-　　高常恍然大悟，原来自己的义兄担忧得是这个。他倒对这种事情并不在意：他从小就是孤儿，光棍一个，无牵无挂，去哪里都是一样。不过义兄拖家带口的，设身处地的想也的确瞻前顾后了。
+Gao Chang suddenly understood. So this was what his sworn brother was worried about. He didn't care about such things: he had been an orphan since he was a child, a bachelor with no ties, and it was the same for him wherever he went. But his sworn brother had a family to support, and thinking from his perspective, it was indeed a matter of looking before and after.
 
-　　“兄长顾虑的是。不过照小弟看来，走也就走了罢。这大明虽好，又不是我等的大明。在这里是当奴才，到澳洲也不过是当奴才，又能坏到哪里去？这几位老爷心地又好，兄长全家跟了去，断然不会吃亏。”他笑了笑，“我若是兄长的话，要去便跟得去，也好见识见识这澳洲海外小中华的风情。”
+"Brother's concerns are valid. But in my humble opinion, if they go, then just go. This Great Ming is good, but it is not our Great Ming. Here we are slaves, and in Australia we will also be slaves. How much worse can it get? These masters are kind-hearted. If your whole family follows them, you will certainly not suffer a loss." He smiled, "If I were you, brother, if they go, I would follow. It would be good to see the customs of this Little China overseas."
 
-　　“兄弟说得也是，不过我不想客死他乡啊。”高青长叹了一声，“当年家乡闹饥荒为了求条生路，弃了老宅祖坟逃荒，蒙高老爷收留到了这里，一晃都已经十多年了。房子、祖辈的坟地，也多半都湮灭了……我已经断了回乡的念头……”他说着说着，眼泪都下来了，满声哽咽，“兄长我都过了四十，山高水低就是要走得人，老来还得埋骨海外，那真是死不瞑目了。”
+"What you say is true, brother, but I don't want to die in a foreign land." Gao Qing let out a long sigh. "Back then, during the famine in my hometown, in order to find a way to live, I abandoned my old house and ancestral graves and fled. I was lucky enough to be taken in by Master Gao and came here. In a flash, more than ten years have passed. The house, the ancestral graves, are probably all gone... I have already given up the idea of returning to my hometown..." As he spoke, tears streamed down his face, and his voice was choked with sobs. "I am already over forty. When the mountains are high and the waters are low, it is time for a person to go. If I have to be buried overseas in my old age, I will truly not be able to die in peace."
 
-　　高常见义兄伤感，忙劝慰了几句。心中却并不以为然。这高家的奴才死了，只有那些有头有脸的奴才，还能仗着主子的赏钱和平时的积蓄，做个道场佛事买块地下葬。一般的奴才不过是赏一口薄皮棺材，抬到城外的义冢地上胡乱埋了了事。义兄想留在这里，难道就是贪图身后的这些？不由得觉得异常凄凉。
+Gao Chang saw his sworn brother's sadness and quickly comforted him with a few words. But in his heart, he did not agree. When a slave of the Gao family died, only those with some status could, with the master's reward and their own savings, have a Daoist or Buddhist ceremony and buy a piece of land for burial. An ordinary slave would only be given a thin coffin and be carried to the public cemetery outside the city to be buried haphazardly. His sworn brother wanted to stay here, was it just for these things after death? He couldn't help but feel extremely desolate.
 
-　　这个混混沌沌当奴才混日子的青年，二十多年来第一次在内心闪过了一缕闪光：这世界，或许不该是这样的……
+This muddle-headed young man who had been a slave his whole life, for the first time in more than twenty years, a glimmer of light flashed in his heart: This world, perhaps it shouldn't be like this...
+
 [y002]: /characters/y002 "文德嗣"
