--- a/_posts/2009-9-27-1-02700.md
+++ b/_posts/2009-9-27-1-02700.md
@@ -1,91 +1,92 @@
 ---
 layout: post
-title: 第二十七节 来了新人
+title: "Section 27: A Newcomer Arrives"
 category: 1
 path: 2009-9-27-1-02700.md
 tag: [normal]
 ---
 
-　　南雄州码头上，停泊着许多大大小小的船只。此处是广东交通南北的水陆码头，凡是南下广东的客商，从江西的南安翻过大庾岭，在南雄州换船，便可一路直下广州。
+On the docks of Nanxiong Prefecture, many boats of all sizes were moored. This place was the water and land hub for traffic between the north and south of Guangdong. All merchants traveling south to Guangdong would cross the Dayu Mountains from Nan'an in Jiangxi, change to a boat in Nanxiong Prefecture, and could then travel straight down to Guangzhou.
 
-　　从北京一路过来的小杨公公——杨天梁一行，坐的是二艘起楼船。一条他和伺候的家人婢仆为主，另外一条，则是随来的师爷、管事、清客、护卫等等。两条船都没亮出旗、牌、纱灯等标示。因为杨公公在宫里非但不是什么红人，自保都快堪忧了。亮出牌子除了招人忌讳之外没别得好处。纵然有些官吏愿意应酬，小杨公公的脾气又最怕迎送。所以，一路或坐轿或行船，到了下处，即不惊动驿站也不投贴。只是默然赶路而已。此刻上了船休息了一天，旅途劳顿已经消失了一半，清客相公们便在船上打牌消遣，也邀了杨天梁去，他一概都推辞了。
+Little Eunuch Yang—Yang Tianliang—and his party, who had come all the way from Beijing, were on two multi-storied boats. One was for him and his serving family members and maids, while the other was for the accompanying secretaries, managers, retainers, and guards. Neither of the two boats displayed any flags, plaques, or gauze lanterns to indicate their status. This was because Eunuch Yang was not only not a favorite in the palace, but was also struggling to protect himself. Displaying their insignia would only attract jealousy and bring no other benefits. Even if some officials were willing to entertain them, Little Eunuch Yang's temperament was most averse to greetings and send-offs. Therefore, along the way, whether by sedan chair or by boat, upon arriving at their lodging, they neither disturbed the post stations nor sent out calling cards. They just traveled silently. At this moment, having rested on the boat for a day, half of the fatigue from the journey had disappeared. The retainer-scholars were playing cards on the boat to pass the time and also invited Yang Tianliang to join, but he declined all of them.
 
-　　不是他厌恶这雀战之戏。实在是这次南下，心里别有一番滋味。
+It was not that he disliked the game of sparrows. It was that this trip south had a special flavor in his heart.
 
-　　杨天梁是万历晚年选进的宫，拨在杨公公的手下，颇受他的器重认了义子。杨公公又是高时明的亲信之一，本来他靠着这可二棵大树，在宫里算是前途光明。没想到九千岁一用事，高时明公公去职养老，义父不是给打发到陵工上挖坑，就是在宫里闲置居住，自己也有三四年没正经差使，幸亏过去的人脉尚在，得了一个经厂掌司的职掌。
+Yang Tianliang had been selected into the palace in the late Wanli reign and was assigned to Eunuch Yang. He was highly regarded by him and was adopted as his godson. Eunuch Yang was also one of Gao Shiming's confidants. Originally, relying on these two great trees, his future in the palace was bright. Unexpectedly, as soon as the Nine-Thousand-Year-Old came to power, Eunuch Gao Shiming resigned from his post to retire. His adoptive father was either sent to dig pits at the imperial tombs or was left idle in the palace. He himself had not had a proper assignment for three or four years. Fortunately, his past connections were still there, and he obtained the position of director of the Sutra Printing Workshop.
 
-　　平日里这父子见面都很少，公事之外就是或是经营自家的产业。对宫闱朝廷的事情不置一言，力求避嫌。
+Usually, the father and son rarely met. Outside of official business, they were either managing their own properties. They did not say a word about the affairs of the palace and the court, striving to avoid suspicion.
 
-　　然而这些年九千岁的权势滔天，他们父子的日子也一天比一天难过起来。眼看着朝堂上的酸子们不是战栗归命，就是去职贬官。从去年闰六月开始，以浙江巡抚潘汝桢上疏为魏忠贤立生祠为发端，各地官吏纷纷请立，一时间已经有了四十余处。这让一直闲曹冷差的杨公公动了心。
+However, in these years, the power of the Nine-Thousand-Year-Old was overwhelming, and the days of the father and son became more and more difficult. Seeing the sour scholars at court either tremble and submit, or be dismissed from office and demoted, from the intercalary sixth month of last year, starting with the Zhejiang governor Pan Ruzhen's memorial to build a living shrine for Wei Zhongxian, officials from all over the country纷纷 requested to build them. In a short time, there were already more than forty. This moved Eunuch Yang, who had been in a cold and idle position for a long time.
 
-　　眼下请立生祠都是朝廷和各地文武官员，宫中太监还没有发端的，若是自己也参与一脚？且不说有可能让九千岁的观感大变咸鱼翻身，至少也能留个恭顺的印象。
+Currently, those requesting to build living shrines were all court officials and local civil and military officials. No eunuch in the palace had yet taken the lead. What if he also got involved? Not to mention the possibility of making the Nine-Thousand-Year-Old's impression of him change dramatically and making a comeback, at least he could leave an impression of being respectful.
 
-　　但是再一想又不妥当，他不是九千岁的亲信，这么搞不但突兀，而且大大冒犯了魏忠贤宫中亲信——拍马屁也不能抢人家的风头。思来想去，官吏士绅早就有发起修祠堂的了，只有商民这一块还没什么动静，可以发动。自己在广州有高举这个棋子，最近他又孝敬了不少海外新奇之物，想来发了不小的财，就借他的财由他出面去做这事情好了。
+But on second thought, it was not appropriate. He was not a confidant of the Nine-Thousand-Year-Old. To do so would not only be abrupt, but would also greatly offend Wei Zhongxian's confidants in the palace—one could not steal the limelight from others when flattering. After thinking it over, officials and gentry had already initiated the construction of shrines. Only the merchant class had not yet made a move. He could mobilize them. He had Gao Ju as a pawn in Guangzhou. Recently, he had also presented many novel overseas items, so he must have made a considerable fortune. He would just use his wealth and have him come forward to do this.
 
-　　杨天梁就是在这样的情形下，被打发到广州来的。按他义父的吩咐，这个准备建在广州的生祠，不但要规模闳丽，还得表现出商民“发乎至诚”的诚意。照眼下的局势，只要高举起头联络一批商人上书，这事情广东地方官员决不敢拒绝。
+It was under these circumstances that Yang Tianliang was sent to Guangzhou. According to his adoptive father's instructions, this living shrine to be built in Guangzhou not only had to be grand in scale, but also had to show the "utmost sincerity" of the merchants. According to the current situation, as long as Gao Ju took the lead and contacted a group of merchants to submit a petition, the local officials in Guangdong would definitely not dare to refuse.
 
-　　至于这个“规模闳丽”的生祠要用多少钱，杨公公是管不着的，反正高举受他的照顾这么多年，出点血也是应该的——他们总是共荣共损的一体。
+As for how much money this "grand and magnificent" living shrine would cost, Eunuch Yang couldn't be bothered. Anyway, Gao Ju had been under his care for so many years, it was only right for him to bleed a little—they were always a body of shared prosperity and loss.
 
-　　不过，杨天梁却不这么看。他想得比义父要深一层。世间的荣枯轮回从无例外，九千岁如今是鲜花着锦，烈火烹油的态势，这点子锦上添花他也不在眼里；万一败落下去，对景可就成了洗刷不掉的铁证！
+However, Yang Tianliang did not see it that way. He thought a layer deeper than his adoptive father. There are no exceptions to the cycle of prosperity and decline in the world. The Nine-Thousand-Year-Old was now in a state of flowers on brocade, oil on a blazing fire. He wouldn't even notice this little bit of adding flowers to the brocade. But if he were to fall, this would become an ironclad proof that could not be washed away!
 
-　　想到这里，他不由得打了个寒颤。四处张望了一下。他很怀疑自己的随行人员里有东厂的番子，就算想想这样的事情，也都会让人冷汗直冒。
+At this thought, he couldn't help but shiver. He looked around. He highly suspected that there were agents of the Eastern Depot among his entourage. Even just thinking about such things made him break out in a cold sweat.
 
-　　一路上虽然埋头赶路，杨天梁每天都在想这事情该怎样进退才能两全其美。他感到自己的义父在目光太过短浅，总想个钱的事情，觉得叫高举出钱办事就完了，这事情办完了呢？堂堂的九千岁生祠，到底是丰碑还是铁证，就得看造化了——皇上是万岁，皇上的身子骨，可不像是能千秋万代的样子……
+Although he had been rushing on his journey, Yang Tianliang thought every day about how to advance and retreat in this matter to achieve the best of both worlds. He felt that his adoptive father was too short-sighted, always thinking about money, thinking that it would be over once he had Gao Ju pay for it. What about after this matter was over? The grand living shrine of the Nine-Thousand-Year-Old, whether it would be a monument or an ironclad proof, would depend on fate—the emperor was ten thousand years old, but the emperor's health did not seem like it could last for a thousand autumns and ten thousand generations...
 
-　　如何呢？他疲乏的按了按眉心，靠在椅子上养了一会神。
+What to do? He wearily pressed his brow and leaned back in his chair to rest for a while.
 
-　　一个伺候的小监，蹑手蹑脚的进来，见他正闭目养神，不敢说话只静候着。杨天梁却知道有人进来，哼了一声：
+A young eunuch who was serving him tiptoed in. Seeing him with his eyes closed in rest, he did not dare to speak and just waited quietly. But Yang Tianliang knew someone had come in and snorted:
 
-　　“什么事？”
+"What is it?"
 
-　　“回老爷，高大官人的管事在码头上候见多时了。”
+"Replying to master, Master Gao's manager has been waiting at the dock for a long time."
 
-　　“叫他进来。”
+"Let him in."
 
-　　管事的进来给他磕了头，杨天梁认得这是经常到京里给他们送东西的高也高管事，人年轻，说话做事漂亮，是个交际上的人物。
+The manager came in and kowtowed to him. Yang Tianliang recognized him as Manager Gao Ye, who often came to the capital to deliver things to them. He was young, spoke and acted beautifully, and was a sociable person.
 
-　　高也除了替高老爷在这里迎候问安，还随带了一船的酒食和用具，精洁华美。另带有几个男女小伶以作路上消遣。
+Besides welcoming and greeting on behalf of Master Gao, Gao Ye also brought a boatload of food, wine, and utensils, all exquisite and beautiful. He also brought a few young male and female actors for entertainment on the road.
 
-　　最最奇特的，却是一个细木盒子，高也是最后呈送上来的，说是高老爷的一点心意，特意重金从澳洲商人那里买的。
+The most peculiar thing, however, was a small wooden box. Gao Ye presented it last, saying it was a small token of Master Gao's esteem, specially bought from the Australian merchants at a high price.
 
-　　澳洲商人这个名头，杨天梁早就耳熟能详了。开春的时候，高举就在书信里说：广州城内新来了一些澳洲海商，颇有新奇之货。还进了一些东西过来：水晶镜子、一拨弄就能起火的打火机……
+The name "Australian merchants" was something Yang Tianliang had long been familiar with. In the spring, Gao Ju had mentioned in a letter that some new Australian sea merchants had come to Guangzhou with some novel goods. He had also sent some things over: crystal mirrors, lighters that could start a fire with a flick...
 
-　　揭开这个螺甸雕漆的小木盒，里面镶着二个金黄色的小盒子，光芒灿灿，却又非金非玉，盒子中间有三个怪异的花纹，看不出是什么东西。中间另外镶着一个小蜡烛台式的东西，似乎是乌银镶嵌，不过雕工很拙劣，纹样也简陋。
+He opened the small, mother-of-pearl inlaid lacquer box. Inside were two small golden boxes, shining brightly, but they were neither gold nor jade. In the middle of the boxes were three strange patterns, and he couldn't tell what they were. In the middle was another small candlestick-like object, which seemed to be inlaid with niello, but the carving was very clumsy and the pattern was simple.
 
-　　他探询了一眼高也，只见他轻手轻脚的取出一个纸盒，小心的翻开盖子，里面是一张亮晶晶的银纸，剥开纸，却是一排整整齐齐的白色小棍。一股香气飘逸出来。
+He looked questioningly at Gao Ye, who gently took out a paper box, carefully opened the lid, and inside was a sheet of shiny silver paper. Peeling off the paper revealed a neat row of small white sticks. A fragrant smell wafted out.
 
-　　“是烟？”杨天梁的一个小嗜好就是抽烟，立刻就辨识出这是烟草的气味。
+"Is it tobacco?" One of Yang Tianliang's small hobbies was smoking, and he immediately recognized the smell of tobacco.
 
-　　“这是澳洲来的纸烟。我家老爷特意孝敬您的。”说着恭恭敬敬的抽出一支，送到他面前。
+"This is paper-wrapped tobacco from Australia. My master specially presents it to you." With that, he respectfully took one out and presented it to him.
 
-　　杨天梁托着这烟，见其通体雪白，一端露着口，是淡金色的烟丝，一头却是雪白的，类似丝棉一般压紧。一时间也不知道该如何下手，他抽烟用烟袋杆，西洋人贩运来的鼻烟也闻过，就没见过这样的。
+Yang Tianliang held the cigarette. It was snow-white all over. One end was open, revealing light golden tobacco shreds. The other end was snow-white, tightly packed like silk floss. For a moment, he didn't know what to do with it. He smoked with a pipe, and had also smelled the snuff transported by the Westerners, but he had never seen anything like this.
 
-　　在高也的演示下，才算把烟卷衔在口中，用那个烛台般的打火机引着了，吸了一口，觉得烟丝极普通，气味偏淡不说，还夹杂着不知什么的香气。只是那纸卷烟丝一明一灭，不熄不掉，着实稀奇。
+Under Gao Ye's demonstration, he finally held the cigarette in his mouth, lit it with the candlestick-like lighter, and took a puff. He felt that the tobacco was very ordinary, the taste was rather light, and it was mixed with some unknown fragrance. But the way the paper-wrapped tobacco burned, glowing and dimming without going out or falling apart, was truly strange.
 
-　　“不过是纸卷烟丝罢了，还这么乔模乔样的。和上次你家老爷进的澳洲打火机一个德性。”杨天梁虽这么说，对纸烟还是喜欢的紧。爱不释手的摆弄着烟盒：这东西若是能进给当朝的达官贵人是件好礼物。
+"It's just paper-wrapped tobacco, yet it's so pretentious. The same virtue as the Australian lighter your master sent last time." Although Yang Tianliang said this, he was very fond of the cigarettes. He played with the cigarette case in his hand, unable to put it down: this would be a good gift to present to the high officials and dignitaries of the current court.
 
-　　“高管事，这纸烟澳洲海商那里还有么？”
+"Manager Gao, are there more of these paper-wrapped cigarettes from the Australian sea merchants?"
 
-　　“有、有。海商们带来的不少。”
+"Yes, yes. The sea merchants brought quite a lot."
 
-　　“那好，到了广州替咱预备上个几十盒的，那个打火机也得配上。”
+"That's good. When we get to Guangzhou, prepare a few dozen boxes for me, and that lighter must be included."
 
-　　“小的明白。”
+"I understand."
 
-　　见小杨公公不再说话，又闭起了眼睛。高也才慢慢的退了出来。
+Seeing that Little Eunuch Yang was no longer speaking and had closed his eyes again, Gao Ye slowly withdrew.
 
-　　小杨公公的船慢慢的沿江而下的时候，穿越众又倒卖了一批货物，纸烟便是新开发的品种。[文德嗣][y002]乘机向高老爷提出要求，把高常也买了过来。这件事情虽然大家也想过各种瞒天过海的计划，考虑来考虑去，总是无法瞒过的，与其搞这样偷偷摸摸的小动作徒然遭忌，还不如堂堂正正的阳谋。高老爷有些意外，但想来这是高青的请托——给这个不成气的义弟谋个出路——高常也不是什么心腹人物，很痛快的答应了，连身价银子也没要。
+As Little Eunuch Yang's boat slowly sailed down the river, the transmigrators sold another batch of goods. Cigarettes were a newly developed product. [Wen Desi][y002] took the opportunity to ask Master Gao to sell Gao Chang to them as well. Although everyone had thought of various plans to do this secretly, after considering it over and over, they always found it impossible to hide. Rather than engaging in such sneaky little actions that would only arouse suspicion, it was better to be open and aboveboard. Master Gao was somewhat surprised, but he thought it was a request from Gao Qing—to find a way out for this good-for-nothing sworn brother. Gao Chang was not a key figure, so he readily agreed and didn't even ask for a price.
 
-　　高常带了个铺盖自己过来，见过主人便说要改姓文。穿越众对这类问题根本没想过，现在高常提出来了，倒意识到改姓很要紧，是奴仆对主人产生归属感的手段。不过改姓文不大妥当，毕竟穿越行动是大家的。正商量着，[萧子山][y001]提议：与其改什么莫名其妙的姓，不如干脆恢复他的本姓好了，这样能收买人心——中国人对祖宗的事情一向看得很重，失掉自己的姓氏，那是奇耻大辱，认祖归宗则是极大的荣耀。
+Gao Chang came over with his own bedding. After meeting his new masters, he said he wanted to change his surname to Wen. The transmigrators had not thought about this kind of problem at all. Now that Gao Chang brought it up, they realized that changing one's surname was very important, a means for a servant to develop a sense of belonging to the master. However, changing his surname to Wen was not very appropriate, as the transmigration operation belonged to everyone. As they were discussing it, [Xiao Zishan][y001] proposed: instead of changing to some inexplicable surname, it would be better to simply restore his original surname. This would win his heart—Chinese people have always taken matters of ancestry very seriously. To lose one's own surname was a great shame, while to recognize one's ancestors was a great honor.
 
-　　问了他的想法，居然让这个大小伙子跪下了乒乒乓乓的磕了好几个响头，眼泪流了一脸。
+When they asked his opinion, the big young man actually knelt down and kowtowed several times with a loud thud, tears streaming down his face.
 
-　　“蒙老爷们恩典，复了奴才的本姓，我孙常自此就是老爷们的人了，水里水里火里火里，但凭老爷们吩咐！”
+"I am grateful for the masters' grace in restoring my original surname. From now on, I, Sun Chang, belong to the masters. Through water and fire, I will do whatever the masters command!"
 
-　　“我等若要回澳洲去，一去不返呢？”
+"What if we were to return to Australia, and never come back?"
 
-　　“老爷们去到哪里，孙常就跟到那里，天涯海角，绝无二辞！”孙常说得斩钉截铁。
+"Wherever the masters go, Sun Chang will follow, to the ends of the earth, without a second word!" Sun Chang said with determination.
 
-　　原以为收小弟很难，这么容易？俺们的王八之气终于冒了出来！
+They had thought it would be very difficult to recruit a follower. Was it this easy? Our protagonist aura has finally emerged!
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
