--- a/_posts/2009-9-3-1-00300.md
+++ b/_posts/2009-9-3-1-00300.md
@@ -1,68 +1,69 @@
 ---
 layout: post
-title: 第三节 掘金——高举之惑
+title: "Section 3: Digging for Gold - Gao Ju's Confusion"
 category: 1
 path: 2009-9-3-1-00300.md
 tag: [normal]
 ---
 
-　　“愿大能的穿越之神保佑我们，愿时空管理局批准我们的行动。阿门。”
+"May the almighty God of Transmigration bless us, may the Time-Space Administration Bureau approve our actions. Amen."
 
-　　[文德嗣][y002]喃喃念完，背着突击包第一个穿过了虫洞，紧接着，是[萧子山][y001]和[王洛宾][y003]。
+[Wen Desi][y002] muttered the words, then, shouldering his assault pack, he was the first to step through the wormhole, followed closely by [Xiao Zishan][y001] and [Wang Luobin][y003].
 
-　　[文德嗣][y002]是个驴友，平时家里有整套的野营旅行装备，算是装备精良。不过他只选择了快干服，救生盒和一把多用途刀，另外带了一个突击包用来随身携带虫洞出口。
+[Wen Desi][y002] was an avid hiker and had a full set of camping and travel gear at home, making him well-equipped. However, he only chose to bring quick-dry clothing, a survival kit, a multi-purpose knife, and an assault pack to carry the wormhole exit.
 
-　　至于武器，[文德嗣][y002]考虑过他的全钢弩机和猎刀，但是想了下，真发生什么事情，三个城市宅男和明代人比力气斗狠恐怕有点玄，反正虫洞出口可以随意移动，发生危险直接打开虫洞逃命就是。慎重起见，[文德嗣][y002]拿出了三件防刺背心，又搞了一些烟幕弹，外加电击器，紧急的时候可以用来脱身。
+As for weapons, [Wen Desi][y002] had considered his all-steel crossbow and hunting knife, but then thought that if something really happened, it would be a bit of a stretch for three urban nerds to compete in strength and ferocity with people from the Ming Dynasty. In any case, the wormhole exit could be moved at will, so if danger arose, they could just open the wormhole and escape. To be cautious, [Wen Desi][y002] took out three anti-stab vests, some smoke bombs, and stun guns, which could be used to get away in an emergency.
 
-　　[萧子山][y001]没这方面的装备，直接去满街都有的军品劳保店买了一身作训服，一双高帮的解放靴，仿制的军用背包。
+[Xiao Zishan][y001] had no such equipment. He went directly to one of the many military surplus and labor protection stores on the street and bought a set of training clothes, a pair of high-top Jiefang boots, and a replica military backpack.
 
-　　[王洛宾][y003]穿的是常用的野外工作服。每个人都带了二天分的压缩干粮和几瓶纯净水。还带了些应急的药物。这只是为了尽量减少打开虫洞的机会，以免暴露。
+[Wang Luobin][y003] wore his usual outdoor work clothes. Each person brought two days' worth of compressed biscuits and a few bottles of purified water. They also brought some emergency medicine. This was just to minimize the chances of having to open the wormhole, to avoid exposure.
 
-　　[萧子山][y001]拉来的促销品种类很多，开始打算就带上玻璃杯和塑料粉盒，后来还是觉得每样都带点比较好——毕竟并不清楚明人的审美趣味和需求，多带点样品探探路。
+[Xiao Zishan][y001] had brought a wide variety of promotional items. At first, they planned to only bring glass cups and plastic powder boxes, but later they thought it would be better to bring a little of everything—after all, they didn't know the aesthetic tastes and needs of the Ming people, so it was better to bring more samples to test the waters.
 
-　　确定穿越地点后[萧子山][y001]去了几次图书馆，大体查到了濠畔街现在的位置，在其附近找了间快捷酒店，租了一个房间。接着，[文德嗣][y002]连续几天在夜间稍稍打开一下虫洞，观察对面的环境——濠畔街毕竟是个商业区，人烟稠密。随意打开虫洞，保不定会落在谁家的卧室或者干脆就在人来人往的大街上。保险起见，[文德嗣][y002]干脆从网上订购了红外夜视眼镜。地点不适合就得再换地方——完全是撞大运。
+After determining the crossing point, [Xiao Zishan][y001] went to the library several times and roughly found the current location of Haopan Street. He found a budget hotel nearby and rented a room. Then, for several days, [Wen Desi][y002] would slightly open the wormhole at night to observe the environment on the other side—Haopan Street was a commercial area, after all, and densely populated. If they opened the wormhole randomly, they might end up in someone's bedroom or right on a busy street. To be safe, [Wen Desi][y002] simply ordered infrared night vision goggles online. If the location was not suitable, they would have to change places again—it was a complete gamble.
 
-　　根据[文德嗣][y002]几次夜间观察，对面的空间应该是某个宅邸的后院，可以看到许多成排的灰砖瓦房，天黑以后根本没人。
+According to [Wen Desi][y002]'s several nighttime observations, the space on the other side should be the backyard of some mansion. He could see many rows of gray brick and tile houses, and it was completely deserted after dark.
 
-　　穿越之后会怎么样，其实大家心里都没底，也没地方咨询。初步的打算是穿过去之后，先在僻静的地方躲一会，天色一亮，就找铺户进去亮出货样，看看对方反应如何。
+No one really knew what would happen after they crossed over, and there was nowhere to consult. The preliminary plan was to hide in a secluded place after crossing over, and as soon as it was light, they would find a shop, show their samples, and see how the other party reacted.
 
-　　17世纪的古人会对这几个奇装异服的人持什么态度：是避而不见还是造成大批不明真相的群众围观都无法预计。还有语言沟通上的障碍，不过，据[文总][y002]说，广州话是保存古汉语成分最多的方言，可能差别不会象现代普通话那么大。
+What attitude the 17th-century ancients would have towards these three strangely dressed people was unpredictable: whether they would avoid them or cause a large crowd of uninformed people to gather. There was also the language barrier, but, according to [Chief Wen][y002], Cantonese was the dialect that preserved the most components of ancient Chinese, so the difference might not be as great as with modern Mandarin.
 
-　　时间确定为凌晨5点左右，也就是古代的卯初，早了，天色未亮，明清二代虽无明确的宵禁制度，但夜生活寂寥，晚间行人稀少，一旦被打更或者查夜的衙役发现即会盘查；晚了，人多起身干营生，被人看到虫洞打开的可能性大大的增加——凭空钻出三个人来，还不轰动全广州。
+The time was set for around 5 a.m., which was the beginning of the mao hour in ancient times. Any earlier, and it would still be dark. Although the Ming and Qing dynasties did not have a clear curfew system, nightlife was quiet, and there were few pedestrians at night. If they were discovered by the night watchman or a patrolling yamen runner, they would be questioned. Any later, and more people would be up and about their business, greatly increasing the possibility of the wormhole being seen opening—three people appearing out of thin air would surely cause a sensation throughout Guangzhou.
 
-　　高举高大老爷这几天总觉得夜里睡不安稳，后面栈房院里的几条狗每到夜间总是叫个不停，护院家丁赶去逻查了几次，并没什么异样。那栈院本身就是堆货的地方，墙壁不但高，而且两边还有偏院夹道，哪怕是一等一的飞贼大盗，要混进人来也没那么容易。于是便有人有疑神疑鬼起来，说院子里半夜常有诡异的光出现，一时间高宅里人心惶惶，白天还好，一到夜里，这栈房成了众人避之不及的地方。这些日子天象也怪异，傍晚总是雷声滚滚，却又不见下雨，天空时常变得诡异的紫色。高老爷也总没好脸色，连平日里最得宠的小妾，都懒得临幸了。
+Master Gao Ju had been feeling that he couldn't sleep soundly at night these past few days. The few dogs in the warehouse yard behind would always bark incessantly at night. The household guards went to check several times, but found nothing unusual. The warehouse yard itself was a place for storing goods. The walls were not only high, but there were also side courtyards and alleys on both sides. Even for a top-notch thief, it would not be so easy to sneak in. Thus, some people became suspicious, saying that a strange light often appeared in the courtyard in the middle of the night. For a time, the Gao residence was in a state of panic. It was fine during the day, but as soon as night fell, the warehouse became a place everyone avoided. The celestial phenomena had also been strange these days. In the evening, there was always rolling thunder, but no rain, and the sky often turned a strange purple. Master Gao was also in a bad mood, and he was too lazy to even favor his most beloved concubine.
 
-　　高大老爷倒不是怕鬼，而是这后院的栈房关系着他的身家性命。濠畔街上大大小小上百的商户，个个都是通番货洋发的财。如今他把去年冬天从佛郎机人手里得来的货物和白银都变成了佛郎机人喜欢的生丝、绸缎、瓷器，还备了许多朝廷明令禁止出口的硝石和铁器，万一真有什么闪失，岂不是要了他的命——要了他的命还是小事，他这偌大的产业，有一半都是宫里杨公公的，杨公公虽然没九千岁那么显赫，要他全家灰飞烟灭也不是难事。
+It wasn't that Master Gao was afraid of ghosts, but that the warehouse in the backyard was a matter of life and death for him. Of the hundreds of large and small businesses on Haopan Street, every single one had made its fortune by trading with foreigners. Now, he had converted all the goods and silver he had obtained from the Franks last winter into raw silk, satin, and porcelain that the Franks liked. He had also prepared a lot of saltpeter and ironware, the export of which was explicitly prohibited by the imperial court. If anything went wrong, wouldn't it be the end of him—and his life was a small matter. Half of his vast enterprise belonged to Eunuch Yang in the palace. Although Eunuch Yang was not as prominent as the Nine-Thousand-Year-Old, it would not be difficult for him to have his entire family wiped out.
 
-　　这天夜里狗倒是颇为安静，再没叫唤。高老爷算是睡了个好觉，这几天因为心绪不宁，他一直在内书房独寝，五更刚过，便起身了，在丫头的服侍下用青盐刷牙盥洗，正眯缝着眼看半明半暗的天色，揣测天气如何，要不要去院里快活一番……
+Tonight, the dogs were quite quiet and didn't bark again. Master Gao had a good night's sleep. Because of his unease these past few days, he had been sleeping alone in his inner study. Just after the fifth watch, he got up. Under the service of a maid, he brushed his teeth with green salt and washed his face. He was squinting at the half-dark sky, wondering about the weather and whether he should go to the courtyard for some fun...
 
-　　后院又是一阵狗的狂吠声，高老爷不由得一惊，早起的舒爽心情被破坏无余，将杯盏重重一顿，正待唤人查问，只见自己的护院头目连滚带爬的直冲进院子。高老爷脸色大变。这里是内书房，男仆非传不得入内，头目这么气急败坏的冲进来，不问可知是出了大事。
+There was another burst of frantic barking from the backyard. Master Gao couldn't help but be startled. His pleasant morning mood was completely ruined. He slammed down his cup and was about to call someone to investigate when he saw the head of his household guards come tumbling and crawling straight into the courtyard. Master Gao's face changed dramatically. This was the inner study, and male servants were not allowed to enter without being summoned. For the head guard to rush in in such a panic, it was obvious that something major had happened.
 
-　　“老爷，老爷，栈房院子……院子里……来了……来了……”
+"Master, Master, the warehouse yard... in the yard... there are... there are..."
 
-　　“急什么，慢慢说。”高老爷多年通洋贩私，早就养成了临危不乱的心境，只慌乱了一下，便镇定了下来。
+"What's the rush? Speak slowly." Master Gao had been smuggling foreign goods for many years and had long since developed a calm demeanor in the face of danger. After a moment of panic, he calmed down.
 
-　　“后院，后院，来了三个倭人！”
+"The backyard, the backyard, three Japanese have come!"
 
-　　听到后院多了三个倭人，高老爷虽然不甚明了这几个倭人是怎么进来的，但是只要是人就好说，便松了口气，道：“几个倭人把你吓得这样！先绑了关在柴房里。”气度不凡的挥了下袖子，脑子里却转了几个弯。
+Hearing that there were three Japanese in the backyard, although Master Gao didn't quite understand how they had gotten in, as long as they were people, it was manageable. He breathed a sigh of relief and said, "A few Japanese have scared you like this! Tie them up first and lock them in the woodshed." He waved his sleeve with an air of importance, but his mind was racing.
 
-　　难道是游鱼洲上的汪老大派来的人，现在有番船泊下了？高举知道佛郎机人多有倭人奴仆，但是现在不是船到的时候，再说，作为他的合作伙伴汪老大也不会事先不打个招呼就把几个倭人送来，更不会偷偷摸摸的塞进他的后院。
+Could they be men sent by Boss Wang from Youyu Island? Has a foreign ship docked? Gao Ju knew that the Franks often had Japanese servants, but it wasn't time for the ships to arrive. Besides, as his partner, Boss Wang wouldn't send a few Japanese over without giving him a heads-up, let alone sneak them into his backyard.
 
-　　“老爷，这几个倭人……着实古怪！”头目赶忙禀告，“小的们不敢妄然动手。”
+"Master, these Japanese... are truly strange!" the head guard hurriedly reported. "We didn't dare to act rashly."
 
-　　“饭桶！废物！”高老爷大怒，心里却有些害怕，他虽是外省客居此地，但是早年间倭寇凶残成性寇掠沿海的往事还是听过不少，这濠畔街之所以现在会圈到城里，也是因为当年倭寇猖獗。这三个人神不知鬼不觉的深夜溜进他的后院，恐怕……高老爷想起听通日的海商说过，日本有些异人武者，惯能隐身潜踪，杀人于无形……
+"Good-for-nothing! Useless!" Master Gao was furious, but he was also a little scared. Although he was a sojourner from another province, he had heard many stories about the ferocious nature of the Japanese pirates who had plundered the coast in the early years. The reason Haopan Street was now enclosed within the city walls was also because of the rampant Japanese pirates back then. For these three people to sneak into his backyard in the dead of night without anyone knowing, perhaps... Master Gao remembered hearing from a sea merchant who knew Japanese that there were some extraordinary warriors in Japan who were skilled in stealth and assassination...
 
-　　想到这里，心中大惧，原先叫家丁抓了再说的念头淡了下去，赶紧着问了句：“这三人现在何处？”
+At this thought, he was greatly frightened. The idea of having his servants capture them first faded away. He quickly asked, "Where are these three people now?"
 
-　　“小的们用弓箭火铳围在后院，”头目看了一眼高老爷的脸色，“看他们的模样，似乎并无歹意……”
+"We have them surrounded in the backyard with bows and muskets," the head guard glanced at Master Gao's face. "From their appearance, they don't seem to have any ill intentions..."
 
-　　“混蛋！”没有歹意跑到他家后院来做什么，难道是来打生抽？
+"Bastard!" If they had no ill intentions, what were they doing in his backyard? Were they here to buy soy sauce?
 
-　　“老爷，这几人并无兵器。这是他们为首一人丢给小的的。”头目赶紧从怀里递过一个小盒，“还说了许多话语，小的听不甚明白。”
+"Master, these men have no weapons. This is a small box that their leader threw to us." The head guard quickly handed over a small box from his bosom. "He also said many things, but I couldn't understand them very well."
 
-　　高老爷半信半疑间将纸盒接过来，却吃了一惊，这盒子入手光洁无比，似乎上了一层釉一般，不过边缘的毛口让他立刻就发现这是个纸盒子。
+Master Gao took the paper box half-believingly, but was startled. The box was incredibly smooth to the touch, as if it had been glazed, but the rough edges immediately told him it was a paper box.
 
-　　心道：果然古怪。小心的拆开盒子，内中却是一个小小的椭圆形扁盒，材质非玉非瓷，也如那纸盒般仿佛有层瓷釉，颜色却是瓷器上从未见过的娇艳无比的粉红，入手很轻。高老爷常年贩卖洋货，见多识广，却怎么也看不出来是什么东西做得。样子倒和妇人所用的粉盒相仿，试着一掀，盒盖如贝壳般应手而启，却见内侧明晃晃的一片，定睛看去，不由得面如死灰！
+He thought to himself: Truly strange. He carefully opened the box. Inside was a small, oval, flat box. The material was neither jade nor porcelain, and like the paper box, it seemed to have a layer of porcelain glaze. The color was a vibrant pink he had never seen on porcelain before, and it was very light in his hand. Master Gao had been dealing in foreign goods for many years and was very knowledgeable, but he couldn't tell what it was made of. It looked similar to a woman's powder box. He tried to lift the lid, and it opened like a clamshell. He saw a bright, shining surface inside. He looked closely, and his face turned ashen!
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
