--- a/_posts/2009-9-6-1-00600.md
+++ b/_posts/2009-9-6-1-00600.md
@@ -1,100 +1,100 @@
 ---
 layout: post
-title: 第六节 克拉克瓷（一）
+title: "Section 6: Kraak Porcelain (Part 1)"
 category: 1
 path: 2009-9-6-1-00600.md
 tag: [normal]
 ---
 
-　　这天晚上，完成了第一次时空之旅的三个人，召开了第一次工作总结会议。按照正式的会议流程做了会议记录。按[文德嗣][y002]的说法：我们正在创造历史。
+That evening, the three men who had completed their first journey through time and space held their first work summary meeting. Meeting minutes were taken according to formal meeting procedures. In [Wen Desi][y002]'s words: "We are making history."
 
-　　会议上，对穿越中的各项问题进行了总结归纳。结论是：过于轻视古人的智慧，功课没做足，对明代了解太少，想当然的成分居多。
+At the meeting, various issues encountered during the transmigration were summarized and concluded. The conclusion was: they had been too contemptuous of the wisdom of the ancients, had not done enough homework, knew too little about the Ming Dynasty, and had relied too much on assumptions.
 
-　　总体来说，运气不错，相当顺利的找到了一个还算合适的代理人。
+Overall, their luck was good, and they had quite smoothly found a reasonably suitable agent.
 
-　　至于下一步的贸易方案，虽然价格低得出乎他们的预料，但是仔细核算下来，利润并没有想象的那么低。
+As for the next trade plan, although the prices were unexpectedly low, a careful calculation showed that the profit was not as low as they had imagined.
 
-　　明代的一两白银，合大约37.3克。本时空的白银的收购价虽然有所浮动，但是每克不过3元上下（销售价3.6－3.8元，收购价在2－2.6元的，取稍高一些的价），一两白银可得112元人民币。实际算上“火耗”成本——明代流通的白银许多都是纯度不高的需要从新融炼，收益更低一些。
+One tael of silver in the Ming Dynasty was equivalent to about 37.3 grams. Although the purchase price of silver in their own time fluctuated, it was only about 3 yuan per gram (with a selling price of 3.6-3.8 yuan and a purchase price of 2-2.6 yuan, they took a slightly higher price). One tael of silver could be exchanged for 112 RMB. In reality, considering the cost of "fire loss"—much of the silver circulating in the Ming Dynasty was of low purity and needed to be re-melted—the return would be even lower.
 
-　　一个粉盒能卖十两的话，也就是说大约可得1000元。[萧子山][y001]拿来的粉盒有200多个，仅此一项，就能收入白银二千两，合二十万元。即使他们要购入这些粉盒，目前的批发价也不过几元一个，成本几乎可以忽略不计。
+If a powder box could be sold for ten taels, it meant they could get about 1000 yuan. [Xiao Zishan][y001] had brought over 200 powder boxes. This item alone could bring in two thousand taels of silver, equivalent to two hundred thousand yuan. Even if they had to purchase these powder boxes, the current wholesale price was only a few yuan each, making the cost almost negligible.
 
-　　“其实我们还可以倒卖一次。”[萧子山][y001]拿笔涂抹了半天，“我记得明末金银比价大概在一兑十这个范畴内。这二千两银子，我们要求兑成黄金。可得二百两，合计7460克。每克按150元计算，就是一百多万。比卖货还赚。”
+"Actually, we can do another round of arbitrage," [Xiao Zishan][y001] scribbled with his pen for a while. "I remember the gold-to-silver price ratio in the late Ming was about one to ten. With these two thousand taels of silver, we can ask for it to be converted into gold. We could get two hundred taels, totaling 7460 grams. Calculated at 150 yuan per gram, that's over a million yuan. That's more profitable than selling the goods."
 
-　　“不过一般来说，社会上的黄金存量是有限的，兑换不到多少的。”[王洛宾][y003]觉得有些可惜。
+"But generally speaking, the stock of gold in society is limited, so we won't be able to exchange much," [Wang Luobin][y003] felt it was a bit of a pity.
 
-　　“其实我们可以要另外一样东西作价，比黄金还值钱。”[文德嗣][y002]说。
+"Actually, we can ask for another thing as payment, something more valuable than gold," [Wen Desi][y002] said.
 
-　　“什么东西？”
+"What is it?"
 
-　　“瓷器。”[文德嗣][y002]指着报纸上佳士得的拍卖公告，“明代的瓷器，不用我说了吧……”
+"Porcelain." [Wen Desi][y002] pointed to a Christie's auction announcement in a newspaper. "Ming Dynasty porcelain, I don't need to say more..."
 
-　　当家丁一脸惨白的跑到书房来的时候，高老爷就知道这澳洲的三位又来了。这次是深夜，和上次一样，凭空从栈房院子里冒了出来。
+When the pale-faced servant ran to the study, Master Gao knew that the three Australians had come again. This time it was late at night, and just like last time, they had appeared out of thin air in the warehouse yard.
 
-　　要不是上次他们是白天来的，而且还是在大白天走的，高老爷真要怀疑他们是什么鬼魅妖物了。
+If they hadn't come during the day last time, and left in broad daylight, Master Gao would have really suspected them of being some kind of ghosts or demons.
 
-　　“高大倌人，这些是货物。”
+"Master Gao, these are the goods."
 
-　　书房廊下，堆着家丁们从栈房院子里搬来的四五个纸箱子。拿纸做货物箱子，他还是第一次看到，心里不由得突突乱跳，虽然前些天他已经偷偷的用鸡血淋过那几件货样，隔天再看，这些东西还是好好的，没有化作土块木偶，这才算安心。
+Under the eaves of the study, there were four or five cardboard boxes that the servants had moved from the warehouse yard. It was the first time he had seen paper used as cargo boxes, and his heart couldn't help but beat wildly. Although he had secretly sprinkled chicken blood on those samples a few days ago, and when he looked at them the next day, the things were still fine and hadn't turned into clay puppets, he was only then relieved.
 
-　　“阎管事，清点造册。”高老爷吩咐手下人。
+"Manager Yan, count and make a list," Master Gao ordered his men.
 
-　　“是，老爷。”
+"Yes, master."
 
-　　管事领着家丁们把纸箱拆开，一件件货物都包着那种精致的纸盒，码放的整整齐齐。高老爷点了点头，这澳洲商贾行事还真是奢侈——光这包装，恐怕就花了不少钱。
+The manager led the servants to open the cardboard boxes. Each item was wrapped in that exquisite paper box, neatly stacked. Master Gao nodded. These Australian merchants were really extravagant—just the packaging probably cost a lot of money.
 
-　　三人坐在椅子上，看着高府的家丁清点。昏惨惨的烛光下，高老爷那南京缎的袍子微微的闪着光，[萧子山][y001]莫名其妙地想起了寿衣，鸡皮疙瘩都起来了。
+The three men sat on chairs, watching the Gao family's servants count. Under the dim candlelight, Master Gao's Nanjing satin robe shimmered slightly. [Xiao Zishan][y001] inexplicably thought of burial clothes, and goosebumps rose on his skin.
 
-　　好在他们已经准备了一件特别的礼物，清点结束，双方一一对过数字。[文德嗣][y002]打开一个盒子，取出一盏煤油灯来。这东西花了他们不少时间才从一个工艺品商店买到，120元，是所有东西里最贵的。只见[文德嗣][y002]从箱子里拿出一听煤油，倒进去，用手边的蜡烛点着一团火苗，没多久，灯焰渐盛，原来昏暗的书房里顿时大放光明。
+Fortunately, they had prepared a special gift. After the counting was finished and both sides had confirmed the numbers, [Wen Desi][y002] opened a box and took out a kerosene lamp. It had taken them a lot of time to buy this from a craft store for 120 yuan, the most expensive of all their items. [Wen Desi][y002] took out a can of kerosene from the box, poured it in, and lit a flame with a nearby candle. Before long, the lamp flame grew brighter, and the originally dim study was instantly illuminated.
 
-　　高老爷和家丁管事，莫不目瞪口呆，这些天澳洲海商带来的任何东西，都没有这个给他们留下的印象深刻。
+Master Gao and his servants were all dumbfounded. Of all the things the Australian sea merchants had brought these days, none had left such a deep impression on them as this.
 
-　　“此乃煤油灯，聊备一格。”
+"This is a kerosene lamp, a small token."
 
-　　“真乃奇物！”高老爷也几步走到跟前，一团白光火焰，亮得刺眼，外面还有全透明的玻璃灯罩。他扭头问道，“此物可是贵处所产，价值几何？”
+"What a marvelous object!" Master Gao also walked a few steps closer. A ball of white flame, dazzlingly bright, with a fully transparent glass lampshade outside. He turned his head and asked, "Is this object produced in your esteemed country? What is its value?"
 
-　　[萧子山][y001]不由得慨叹人类对光明的渴望。他们自以为古人会惊讶的东西，都没引起太大的波澜，反倒是这个已经淘汰出现代社会的煤油灯震动了他们——只不过是因为比蜡烛和油灯都要亮得多。如果高老爷能看到电灯？！[萧子山][y001]对未来的穿越计划顿时充满了信心。
+[Xiao Zishan][y001] couldn't help but sigh at humanity's desire for light. The things they thought would surprise the ancients hadn't caused much of a stir. Instead, it was this kerosene lamp, already obsolete in modern society, that had shaken them—simply because it was much brighter than candles and oil lamps. If Master Gao could see an electric light?! [Xiao Zishan][y001]'s confidence in their future transmigration plan was instantly filled.
 
-　　“确系我国所产，”[文德嗣][y002]笑得很奸商，“二百两足矣。”
+"It is indeed produced in our country," [Wen Desi][y002] smiled like a treacherous merchant. "Two hundred taels will suffice."
 
-　　“奇物，奇物！”高老爷着迷的围着这灯看了又看，又学着[文德嗣][y002]的样子把调节火焰大小的旋钮旋转，见光芒要亮就亮要暗便暗，随心所欲。心中暗暗称奇。他知道这东西虽然造型古怪，又有一个昂贵的玻璃罩子，实则就是寒门小户人家用得灯盏油台之类的东西，然而光芒却胜过十倍以上，即无油臭又没有烟，明暗还能调节，澳洲的巧匠难道都是鲁班复生？
+"Marvelous object, marvelous object!" Master Gao circled the lamp in fascination, looking at it again and again. He then mimicked [Wen Desi][y002]'s action of turning the knob to adjust the flame, seeing the light brighten and dim as he wished. He was secretly amazed. He knew that although this thing had a strange shape and an expensive glass cover, it was essentially the same as the oil lamps used by poor families. However, its light was more than ten times brighter, it had no oily smell or smoke, and the brightness could be adjusted. Were the skilled craftsmen of Australia all reincarnations of Lu Ban?
 
-　　忽然想起一事，又问：“此灯用得油——嗯，煤油，也是澳洲产的么？”
+Suddenly remembering something, he asked again, "The oil this lamp uses—um, kerosene, is it also produced in Australia?"
 
-　　[萧子山][y001]点头，这高老爷真是聪明人，一眼便能见到关键之处。
+[Xiao Zishan][y001] nodded. This Master Gao was truly a smart man, able to see the key point at a glance.
 
-　　“正是。”
+"Indeed."
 
-　　“油价？”
+"The price of the oil?"
 
-　　“十两一瓶。”一瓶其实就是一公升而已。眼下他们并不打算大搞煤油贸易，所以卖得贵些也罢，为以后留出一定的空间。（8.5元/升上海灯用煤油报价）
+"Ten taels a bottle." A bottle was actually just one liter. For now, they didn't plan to engage in large-scale kerosene trade, so it was fine to sell it at a higher price, leaving some room for the future. (8.5 yuan/liter was the quoted price for lamp kerosene in Shanghai).
 
-　　“灯是好灯，不过油……”高老爷面露遗憾之色。
+"The lamp is a good lamp, but the oil..." Master Gao showed a look of regret.
 
-　　“一瓶油，也能点十多个时辰，一个月，也不过一二十两银子，不算太贵。”
+"A bottle of oil can burn for more than ten shichen (20 hours). A month would only cost ten or twenty taels of silver, which is not too expensive."
 
-　　“若油能便宜些，此物我就能大卖……”高老爷心有不甘。
+"If the oil were cheaper, I could sell a lot of this item..." Master Gao was unwilling to give up.
 
-　　[萧子山][y001]只打哈哈，不接他的话茬。高老爷知道这伙澳洲海商是不肯松口了。不过平白得了这个灯，还有附赠的十二瓶煤油，也算落了极大的好处了。他想，也许换成菜油也能用呢，赶明试试看。
+[Xiao Zishan][y001] just laughed and didn't take the bait. Master Gao knew that this group of Australian sea merchants was not going to budge. However, having received this lamp for free, along with the twelve bottles of kerosene that came with it, was a huge benefit. He thought, maybe it would work with vegetable oil, he would try it tomorrow.
 
-　　当下[萧子山][y001]把拆装、保养、装油的方法都演示了一遍。高举命一个小厮在旁看了学了，又照着做了几次，见都无错，便按单核价。
+At that moment, [Xiao Zishan][y001] demonstrated how to assemble, disassemble, maintain, and fill the lamp. Gao Ju ordered a young servant to watch and learn, and then do it a few times himself. Seeing that there were no mistakes, he then calculated the price according to the list.
 
-　　货款按他们谈好的价格，结算下来，共得白银三千多两，[萧子山][y001]要求其中一千五两用黄金折算，高老爷连连摇头，说夜里没地方去兑金子，他自己手里也只有五六十两黄金。最后是用六十两金子顶替了六百两白银。
+The payment for the goods, according to the price they had agreed upon, came to a total of more than three thousand taels of silver. [Xiao Zishan][y001] requested that one thousand and five taels of it be converted into gold. Master Gao shook his head repeatedly, saying that there was no place to exchange for gold at night, and he himself only had fifty or sixty taels of gold on hand. In the end, sixty taels of gold were used to replace six hundred taels of silver.
 
-　　[萧子山][y001]又提出要买瓷器，这倒未出乎高老爷的预料，海外商人都喜欢收买瓷器。也不烦难，他的栈房里堆得多了。便命人取了出口用的瓷器几篓过来。
+[Xiao Zishan][y001] then proposed to buy porcelain, which did not surprise Master Gao. Overseas merchants all liked to buy porcelain. It was not difficult either; his warehouse was full of it. He ordered someone to bring over a few baskets of export porcelain.
 
-　　拆开草绳包，取出几件察看，凭[萧子山][y001]突击看过的几本瓷器书，他辨认出这就是所谓的“克拉克瓷”，是晚明有代表性的外销瓷器品种。
+Opening the straw rope wrapping, he took out a few pieces to inspect. Based on the few books on porcelain that [Xiao Zishan][y001] had crammed, he recognized that this was the so-called "Kraak porcelain," a representative type of export porcelain from the late Ming Dynasty.
 
-　　这个瓷器现在能卖多少钱？普通的一个盘子也不会少于几千人民币。2005年12月10日由瑞典人StenSjostrand从南海海域打捞上来，在中国嘉德“明万历号、清迪沙如号海捞陶瓷”专场上拍卖的214件克拉克瓷器。虽然因为长时间在水下浸泡，瓷器釉面严重腐蚀，甚至剥落，还是取得了成交率92%，总成交额272.7万元的业绩。其中一件明万历青花莲瓣形开光花鸟盘拍出了5.5万元。
+How much could this porcelain sell for now? An ordinary plate would not be less than a few thousand RMB. On December 10, 2005, 214 pieces of Kraak porcelain salvaged from the South China Sea by the Swede Sten Sjostrand from the "Ming Wanli" and "Qing Desaru" shipwrecks were auctioned at China Guardian's special auction. Although the glaze of the porcelain was severely corroded and even peeled off due to long-term immersion in water, it still achieved a sales rate of 92% and a total turnover of 2.727 million yuan. One of the Ming Wanli blue-and-white lotus-petal-shaped openwork flower-and-bird plates was sold for 55,000 yuan.
 
-　　此刻，全新的克拉克瓷在他们眼前就有满满的几大篓！
+At this moment, there were several large baskets full of brand-new Kraak porcelain right before their eyes!
 
-　　买下这些瓷器，花了不到二十两银子。[萧子山][y001]他们心中都叫便宜，高老爷则暗笑这几个海商不懂行情。双方都觉得自己捡了大便宜。
+Buying these porcelains cost less than twenty taels of silver. [Xiao Zishan][y001] and the others all thought it was a bargain, while Master Gao secretly laughed at these sea merchants for not knowing the market. Both sides felt they had gotten a great deal.
 
-　　临走之前，[文德嗣][y002]留下二百两银子，要高老爷在临近购置一所房屋，用作他们落脚之用。按计划，虫洞在本时空的出口将暂时安排在那里。高老爷一一允诺。
+Before leaving, [Wen Desi][y002] left two hundred taels of silver and asked Master Gao to purchase a house nearby for them to use as a base. According to the plan, the exit of the wormhole in this time and space would be temporarily located there. Master Gao agreed to everything.
 
-　　澳洲海商走了之后，高老爷一个人在书房里想了很久，连请他来安歇的小妾也给赶了出去。买房，以他的能力，自然不算什么，但是这些人一直身份不明，还是让他有些担心。转了几个圈子之后，把管事的叫来，吩咐澳洲海商的事情不许走漏出去。又叫他把知晓此事的家丁、小厮和丫环都列了单子拿进来，走漏了风声就严查重责。
+After the Australian sea merchants left, Master Gao thought for a long time alone in his study, even sending away the concubine who had come to invite him to rest. Buying a house was naturally not a big deal for him, but the unknown identity of these people still made him a little worried. After pacing a few circles, he called his manager and ordered that the matter of the Australian sea merchants not be leaked. He also asked him to make a list of all the servants, pages, and maids who knew about this matter. If the news leaked, there would be a strict investigation and severe punishment.
 
-　　【注：克拉克瓷的知识来自马未都先生的书。】
+[Note: The knowledge about Kraak porcelain comes from Mr. Ma Weidu's book.]
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
-[y003]: /characters/y003 "王洛宾"
