--- a/_posts/2009-9-7-1-00700.md
+++ b/_posts/2009-9-7-1-00700.md
@@ -1,66 +1,67 @@
 ---
 layout: post
-title: 第七节 克拉克瓷（二）
+title: "Section 7: Kraak Porcelain (Part 2)"
 category: 1
 path: 2009-9-7-1-00700.md
 tag: [normal]
 ---
 
-　　[文德嗣][y002]在本时空把黄金脱手之后，因为质地不够纯，卖出差不多二十七万元。又找了个小冶炼厂，把白银从新熔炼了一下，铸成标准的925工业银，也卖了二十万元。
+[Wen Desi][y002], after selling the gold in this time-space, received nearly 270,000 yuan because the purity was not high enough. He then found a small smelter, had the silver re-melted into standard 925 industrial silver, and sold it for another 200,000 yuan.
 
-　　至于那几大篓瓷器，放在酒店房间也不是办法，但是一下子运走又没法解释房间里怎么会多出这么多的东西，只好多住了几天每天三个人轮流用旅行箱运。
+As for the several large baskets of porcelain, leaving them in the hotel room was not a solution, but moving them all at once would be impossible to explain how so much stuff suddenly appeared in the room. So they had to stay for a few more days, with the three of them taking turns transporting them in suitcases every day.
 
-　　瓷器清点了一下，一共是二百件，大部分是各式各样的盘子，也有不少碗和花瓶。虽然他们知道这是克拉克瓷，但是对文物这行毕竟都是门外汉。
+After counting, there were a total of two hundred pieces of porcelain, mostly various kinds of plates, but also many bowls and vases. Although they knew it was Kraak porcelain, they were after all amateurs in the antiques business.
 
-　　[文德嗣][y002]想到过去在饭桌上结识过一位马教授，就在本地某著名大学历史系任教，也爱玩个古董之类，在收藏界小有名气。狂翻了一阵名片本之后，找到了马教授的电话，约在中午一起吃饭，谈点事情。
+[Wen Desi][y002] remembered a Professor Ma he had met at a dinner party in the past. He taught in the history department of a famous local university and also enjoyed collecting antiques, having a small reputation in the collection circle. After frantically flipping through his name card book, he found Professor Ma's phone number and arranged to have lunch with him to discuss something.
 
-　　“没错，这就是克拉克瓷，”马教授端详了手里的磁盘，“典型的外销瓷。这种瓷的特点是宽边，以青花瓷为多，在盘、碗的口沿画分格和圆形开光的山水人物花卉果实之类的纹饰。”
+"That's right, this is Kraak porcelain," Professor Ma said as he examined the plate in his hand. "A typical export porcelain. The characteristic of this type of porcelain is its wide rim, mostly blue and white, with decorations of landscapes, figures, flowers, and fruits painted in divided sections and circular medallions on the rim of the plates and bowls."
 
-　　[文德嗣][y002]做出一副虚心受教的态度。
+[Wen Desi][y002] put on an attitude of humbly receiving instruction.
 
-　　“克拉克瓷在年代上有万历和康熙之分。你这个是万历的，纹样里凡是勾勒圆圈，都是用两笔拼凑而成，是明末清初瓷画的一个特点。”
+"Kraak porcelain is divided into Wanli and Kangxi periods by date. This one of yours is from the Wanli period. In the patterns, all the circles are pieced together with two strokes, which is a characteristic of porcelain painting from the late Ming and early Qing dynasties."
 
-　　[文德嗣][y002]想这个明明是天启年的。
+[Wen Desi][y002] thought to himself that this was clearly from the Tianqi era.
 
-　　“那这个瓷盘价值不小喽？”
+"So this porcelain plate is quite valuable then?"
 
-　　“不要一说到文物就想到钱嘛。”马教授露出了鄙夷的神情，“文物的价值主要是它的历史和文化内涵。”
+"Don't just think about money when it comes to cultural relics," Professor Ma said with a look of disdain. "The value of a cultural relic is mainly its historical and cultural connotation."
 
-　　说着翻来覆去地看着，有点爱不释手的样子，忽然又微微皱眉：“这个盘子火气未褪，不会是高仿吧？你从哪里搞来的？”
+He turned it over and over in his hands, looking at it with a bit of fondness. Suddenly, he frowned slightly: "This plate hasn't lost its 'fire' yet. It couldn't be a high-quality fake, could it? Where did you get it?"
 
-　　[文德嗣][y002]想我总不能说是从另一个时空弄来的出窑不久的新货。“去乡下办事的时候看到有老乡摆摊，花纹挺特别的，就收了几件。”
+[Wen Desi][y002] thought, *I can't possibly say I got it from another time-space, fresh from the kiln.* "I saw a villager selling it at a stall when I was on business in the countryside. The pattern was quite special, so I bought a few pieces."
 
-　　“你注意到这点很仔细。”马教授赞赏地点点头，“克拉克瓷实际上是一种来样加工的产品，花纹装饰都是迎合欧洲人的审美需求的，有的直接就是按欧洲人的设计的纹样花的。”
+"You were very observant to notice that." Professor Ma nodded in appreciation. "Kraak porcelain is actually a product made to order. The patterns and decorations are all catered to European aesthetic tastes. Some are even directly based on designs provided by Europeans."
 
-　　“那应该是真得了？”[文德嗣][y002]做出一副急于想知道真伪的样子。
+"So it should be authentic then?" [Wen Desi][y002] put on an eager look, as if anxious to know its authenticity.
 
-　　“应该是。”马教授沉吟了一下，“不过这种瓷器在国内存量并不多，市场上的货多数都是从海里捞出来的。但是这盘子明显没浸过水。”
+"It should be," Professor Ma pondered for a moment. "However, the stock of this kind of porcelain in the country is not large, and most of the goods on the market are salvaged from the sea. But this plate has clearly not been soaked in water."
 
-　　“如果是真得，现在行情怎么样呢？”
+"If it is authentic, what is the market price like now?"
 
-　　“这个嘛，陶瓷的行情比较复杂，最近又总体偏冷。不过克拉克瓷算是热门货，成交率是陶瓷里最高的，但是单件价值不算大，这样一个盘子，大概能卖个三四千吧。”
+"Well, the market for ceramics is rather complicated, and it has been generally sluggish recently. But Kraak porcelain is a hot item, with the highest sales rate among ceramics. However, the value of a single piece is not that great. A plate like this could probably sell for three or four thousand yuan."
 
-　　“那也不错了。”[文德嗣][y002]做出一副拾到便宜货的得意劲。
+"That's not bad either." [Wen Desi][y002] put on a smug look as if he had found a bargain.
 
-　　“就是这真假有点说不清，”马教授舒坦着身体靠在椅背上，眼镜后面露出微妙的笑容，“你这盘子吧，怎么看怎么有，就是带火气。按说克拉克瓷很少见高仿，埋雷的事情还没听说过。”
+"It's just that the authenticity is a bit unclear," Professor Ma leaned back comfortably in his chair, a subtle smile behind his glasses. "This plate of yours, no matter how you look at it, it has all the characteristics, but it still has that 'fire'. Generally speaking, high-quality fakes of Kraak porcelain are rare, and I haven't heard of any cases of 'buried mines' (traps for collectors)."
 
-　　[文德嗣][y002]一副心急火燎的模样：“马教授您看这东西到底真不真啊？”
+[Wen Desi][y002] looked anxious: "Professor Ma, do you think this thing is real or not?"
 
-　　马教授想了一会：“这样吧，我有个朋友是专搞瓷器收藏的，在这个圈子里是行家，我给你个号码，你自己约他看看。要是真东西，他肯定要。”
+Professor Ma thought for a while: "How about this, I have a friend who specializes in porcelain collection. He is an expert in this circle. I'll give you his number, and you can make an appointment with him to have a look. If it's the real thing, he will definitely want it."
 
-　　马教授介绍的专家也姓马，不过和马教授不是亲戚，算是玩收藏圈子里的大拿。[文德嗣][y002]的东西一拿过去，二百件东西就都要了。行家很怀疑[文德嗣][y002]是不是在福建挖到了瓷窖。因为这位老文，不但东西品相极好，而且话里的意思是东西还有得是。马行家知道克拉克瓷因为价格适中，出手相当容易。有稳定的货源，自然是求之不得。便说有货继续可以拿来。
+The expert Professor Ma introduced was also named Ma, but he was not a relative of Professor Ma. He was considered a big shot in the collection circle. As soon as [Wen Desi][y002] brought his things over, the expert wanted all two hundred pieces. The expert was very suspicious that [Wen Desi][y002] had dug up a porcelain cellar in Fujian, because not only were Old Wen's items in excellent condition, but his words also implied that there were more to come. Dealer Ma knew that because the price of Kraak porcelain was moderate, it was quite easy to sell. Having a stable source of goods was naturally something he couldn't ask for more. He said that if there were more goods, he could continue to bring them.
 
-　　出手了金银和瓷器，这一趟的收益，差不多就是三百万元。拿这笔钱做启动资金，执委会开始了进一步的行动。
+After selling the gold, silver, and porcelain, the profit from this trip was nearly three million yuan. With this money as startup capital, the Executive Committee began to take further action.
 
-　　再租酒店客房显然不很妥当。[文德嗣][y002]决定办个公司，花了二万代办了全套手续，一个贸易公司就出炉了。[萧子山][y001]这会已经被公司宣布“不再续签劳动合同”，干脆全职负责了，挂上了行政经理的头衔。[文德嗣][y002]也想辞职，可是公司里活多，领导对自己还算不错，不好一走了之，不过好说歹说，终于讲好三个月后离职。[王洛宾][y003]则潇洒的多，一纸辞书就跑广州来了，居然直接进了一家小机械厂去当工人，说是“熟悉下手艺”。
+Renting a hotel room again was obviously not very appropriate. [Wen Desi][y002] decided to set up a company. He spent twenty thousand yuan to have an agent handle all the procedures, and a trading company was born. [Xiao Zishan][y001] had already been informed by his company that his "labor contract would not be renewed," so he simply went full-time, taking on the title of Administrative Manager. [Wen Desi][y002] also wanted to resign, but there was a lot of work at his company, and his boss was quite good to him, so it was not good to just leave. However, after much persuasion, he finally arranged to leave in three months. [Wang Luobin][y003] was much more carefree. He just handed in a letter of resignation and came to Guangzhou. He actually went directly to a small machinery factory to work as a worker, saying he wanted to "familiarize himself with the craft."
 
-　　公司草创一无所有。好在[萧子山][y001]在广州混了不少年，干销售这行接触的人面广，如今手上又有钱，一应事情都好办。办公地点在原来的酒店里租了一间常包商务套房，这种商务常包套房都属于独立的单元。出入不需要经过大厅，比较清静，还配有地下车位，十分方便。[萧子山][y001]把里面一间小仓库作为虫洞的穿越点，单独安装了防盗门。为了适应下一步大批量搬运货物的需求，他买了一辆液压的手推车。
+The company had nothing when it was first established. Fortunately, [Xiao Zishan][y001] had been in Guangzhou for many years. Working in sales, he had a wide range of contacts. Now that he had money, everything was easy to handle. The office was a long-term business suite rented in the original hotel. This kind of business suite was an independent unit. Entry and exit did not require passing through the lobby, it was relatively quiet, and it also came with an underground parking space, which was very convenient. [Xiao Zishan][y001] used a small warehouse inside as the crossing point for the wormhole and installed a separate security door. To meet the needs of moving large quantities of goods in the next step, he bought a hydraulic hand truck.
 
-　　公司的用车上，执委会起了第一个分歧，[萧子山][y001]的意见是买一辆七座类似长安之星的小排量客车。价格低廉，拉人多，又能运货，还省油。[王洛宾][y003]则认为既然之后是要到17世纪去的，那么这样一辆车是没法那个时空发挥余热的——明代没有汽油，路况也不是这样的小车可以跑的，所以他建议是买一辆四驱的柴油动力越野车——相比之下，柴油的替代品是比较容易得到。
+On the matter of the company car, the Executive Committee had its first disagreement. [Xiao Zishan][y001]'s opinion was to buy a seven-seater small-displacement passenger car similar to the Changan Star. It was cheap, could carry many people, could also transport goods, and was fuel-efficient. [Wang Luobin][y003], on the other hand, believed that since they were going to the 17th century, such a car would be useless in that time and space—there was no gasoline in the Ming Dynasty, and the road conditions were not suitable for such a small car. So he suggested buying a four-wheel-drive diesel-powered off-road vehicle—in comparison, a substitute for diesel would be easier to obtain.
 
-　　执委会的三个人就此问题进行了数小时的讨论之后，最终决定了买辆SUV。汽车销售小姐困惑于这几个男人的选择，他们拒绝了更省油的电喷引擎的新款，买了一辆老款的切诺基吉普：四驱、手动档，柴油动力，带自救绞盘。
+After several hours of discussion on this issue, the three members of the Executive Committee finally decided to buy an SUV. The car saleswoman was puzzled by the men's choice. They rejected the newer, more fuel-efficient model with an electronic fuel injection engine and instead bought an old model Cherokee Jeep: four-wheel drive, manual transmission, diesel power, with a self-rescue winch.
 
-　　车有了，赚钱的渠道也有了，下面做什么呢？执委会的三个人坐在会议室的桌子旁，讨论起了下一步计划。
+They had a car, and they had a channel to make money. What to do next? The three members of the Executive Committee sat at the conference room table, discussing their next plan.
+
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
 [y003]: /characters/y003 "王洛宾"
