--- a/_posts/2009-9-8-1-00800.md
+++ b/_posts/2009-9-8-1-00800.md
@@ -1,121 +1,116 @@
 ---
 layout: post
-title: 第八节 台湾还是海南
+title: "Section 8: Taiwan or Hainan"
 category: 1
 path: 2009-9-8-1-00800.md
 tag: [normal]
 ---
 
-　　选择哪里进行穿越？这不仅仅是一个地点，更关系到他们的开局根据地。
+Where to choose to transmigrate? This was not just a location, but also concerned their starting base.
 
-　　一个好的开局，意味着成功的一半。穿越者们基本都爱打游戏，深知战略游戏的一个关键就是在开局的时候获得一个好的基地位置。对于他们来说这个基地要满足：
+A good start is half the battle. The transmigrators, mostly being gamers, were well aware that a key to any strategy game is securing a good base location at the beginning. For them, this base had to satisfy several conditions:
 
-　　1、有良好的农业基础，能保证粮食的供应。
+1.  A good agricultural foundation to ensure food supply.
+2.  A certain population base to meet the labor demands of future industrialization after transmigration.
+3.  Rich natural resources to meet the needs of industrialization.
+4.  Located in a coastal area with a port, as maritime trade was, after all, the easiest way to accumulate wealth in this era.
+5.  Not in the core territory of the Ming Dynasty, otherwise it would inevitably attract a major suppression campaign from the Ming government.
+6.  Not in a contested strategic location. The fledgling transmigrators could not cope with the likes of the Later Jin, Li Zicheng, or Zhang Xianzhong.
+7.  Easy to defend, with natural barriers like mountains, rivers, or the sea.
 
-　　2、有一定的人口基数，能满足未来穿越后工业化的劳动力需求。
+Obviously, in the time and space they were going to, there were not many places that could meet such conditions.
 
-　　3、有丰富的自然资源，能够满足工业化的需要。
+To be cautious, this question was submitted to the discussion board for brainstorming.
 
-　　4、位于沿海地区，有港口，海上贸易毕竟是这个时代最容易聚敛财富的贸易。
+The proposals put forward on the internet basically focused on three places: Taiwan, Hainan, and Australia.
 
-　　5、不能在明朝统治的核心区域，否则必然引起明政府的重点围剿。
+Australia received a great deal of support but was the first to be rejected. Not to mention whether Australia itself was suitable as a base for the transmigrators, the practical reality was that it was simply impossible to get several hundred transmigrators to Australia. It was basically not feasible.
 
-　　6、不在四战之地。后金也好，闯、献之流也好，都不是立足未稳的穿越众能应对的。
+Taiwan was a hot topic of discussion. Whether from the perspective of geographical location, natural conditions, or development potential, it was an excellent choice. The island had no Ming government institutions. Although the Dutch and Spanish had built forts, they could only occupy their own corners, leaving it a vacuum. However, tropical diseases in Taiwan were severe, especially malaria, which to some extent hindered immigration. In the late Ming Dynasty, its development was still very low, and its population was even more sparse, making it impossible to carry out large-scale development without a labor base.
 
-　　7、便于防御，有山川河海之险。
+In comparison, Hainan was much more superior. Since its development from the Six Dynasties, by the late Ming Dynasty, it was already a southern prefecture with hundreds of thousands of registered households. In the tenth year of the Yongle reign, the Han Chinese population alone had 90,000 registered households and a population of 400,000, providing abundant human resources. In terms of agriculture, by the forty-third year of the Wanli reign, the island had 4.1 million mu of official and private fields.
 
-　　显然，在他们要去的那个时空，能满足这样的条件的地方并不多。
+What was even more valuable was that its natural resources were not only abundant but also relatively complete, making it very suitable for industrialization. The island has a total of 88 kinds of minerals (including subspecies), of which 67 have been proven to have industrial development value. Gold, rich iron ore, ilmenite, and zircon are its advantageous minerals.
 
-　　慎重起见，这个问题被提交到讨论版上集思广益。
+The key to the pre-industrial era was coal and iron. Hainan Island has one of China's few large-scale rich iron ore deposits—the Shilu Iron Mine. The ore has an average iron content of 51%, with reserves of 400 million tons. It also has a variety of associated minerals. What is particularly valuable is that the Shilu Iron Mine is almost an open-pit mine. The topsoil can be stripped away for mining, without the need for a costly tunnel system.
 
-　　在网络上大家提出的方案基本集中在三个地方：台湾、海南、澳洲。
+In terms of coal, Hainan only has low-quality lignite. But across the Gulf of Tonkin is Vietnam's Quang Ninh Hong Gai coal mine. In this time-space, the open-pit reserves alone are 200 million tons, and there are billions of tons of high-quality anthracite underground. The coal mine is close to the coast, making sea transportation extremely convenient.
 
-　　澳洲获得了极多的支持，但第一个被枪毙。且不说澳洲本身的是否适合作为穿越者的基地，现实状况也根本不可能把几百个穿越者都弄到澳大利亚去。基本没有可操作性。
+With coal and iron, steel can be produced on a large scale. With steel, the mechanization of various industries can be completed, and then industrial products can be mass-produced.
 
-　　台湾岛，是讨论的热门，无论从地理位置、自然条件、还是发展潜力来看，都堪称是上上选。该岛没有明朝的政权机构，荷兰人和西班牙人虽有筑城，都只能各自盘踞一隅，属于真空带。但是台湾的热带疾病很严重，尤其是疟疾，一定程度上阻碍了移民进入，明末开发程度还很低，人口更是稀少，想搞大规模开发没有人力基础。
+An ancient society might be able to create breathtaking works of art, but it cannot compete with the tide of mass-produced goods from an industrial society.
 
-　　相比之下，海南就优越的多。自从六朝开发以来，到明末这里已经是编户齐民数十万的南陲郡县。永乐十年仅汉族居民就有编户九万，人口四十万，人力资源丰富。农业方面，到万历四十三年，全岛官田民田达到四百一十万亩。
+If Hainan Island had any shortcomings as a transmigration base, it was that it was too close to the mainland. The Ming government's rule in the local area was relatively strict. Except for the Li areas in the interior, most of the island was "under the king's civilization."
 
-　　更为难得的是自然资源不但丰富而且门类比较齐全，非常适合搞工业化。岛上共有各种矿产88种（含亚种），探明有工业开发价值的有67种，金矿、富铁矿、钛铁矿和锆英石矿属优势矿产。
+For such a prefecture that had been registered for many years, the Ming government would not easily give it up and would certainly spare no effort to suppress these ambitious outsiders—whether they were from New Borneo, Australia, or another time-space.
 
-　　前工业化时代的关键是煤与铁。海南岛有中国少有的大型富铁矿——石碌铁矿，矿石平均含铁量51%，储量达四亿吨，它还共生有多种矿产。难能可贵的是，石碌铁矿几乎就是露天的，剥离表层土既可开采，不需要耗资巨大的坑道系统。
+From the very beginning, the transmigrators would face the crusade of the local and Guangdong garrisons. They had to withstand it to gain a firm foothold.
 
-　　煤矿方面海南只有劣质的褐煤，但是渡过北部湾，就是越南的广宁鸿基煤矿，在本时空露天矿储量就有两亿吨，地面下的优质无烟煤有几十亿吨，煤矿近在岸边，海运极其方便。
+Hainan also had a long-term conflict between the Li and Han people. Since the Yuan Dynasty, there had been a Li uprising on the island on average every three years. Less than thirty years before their transmigration in 1627, in the twenty-seventh year of the Wanli reign (1599), the Li people of Ding'an, led by Ma Shi, revolted. The Li people of Dan, Ya, and Lin responded, and the Ming government had to mobilize an army of 100,000 to suppress it. How to live in peace with the local Li people was another problem.
 
-　　有了煤和铁，就能大规模的生产钢，有了钢，就可以完成各项产业的机械化，进而批量化的制造工业产品。
+Finally, piracy was rampant in the history of Hainan. Many county towns in Hainan did not have a north gate. In the late Ming Dynasty, the South China Sea was an era where various Chinese and foreign sea merchants and pirates showed their prowess. Whether they were sea merchants or pirates, they would not miss an opportunity to plunder. Hainan, located on a major maritime route, had long suffered from it. It is conceivable that the transmigrators, with their countless modern tools and supplies, would be a fat sheep coveted by all sides.
 
-　　古代社会也许能制造出叹为观止的艺术品，但是无法与工业社会潮水般的批量制造商品相抗衡。
+In this light, although Hainan had a better foundation than Taiwan, it would also face much greater pressure.
 
-　　如果说海南岛作为一个穿越基地有什么缺点的话，就是它离开大陆实在太近，明政府在当地的统治比较严密，除了内陆的黎区，全岛多数地方都是“王化之地”。
+"In that case, let's choose Taiwan," someone suggested in the online meeting after listening to the Executive Committee's introduction to the situation in Hainan. "Taiwan has malaria, but we can bring quinine, and we can also plant cinchona trees in Taiwan. As for the population, there were so many refugees in the late Ming Dynasty. Using food and land as bait, it wouldn't be a problem to transport a few hundred thousand people over."
 
-　　这样编户齐民多年的府县，明政府不会轻易放弃，一定会不遗余力的来征剿他们这些野心勃勃的外来者——不管他们是新勃泥、澳洲还是另一个时空的来客。
+"Transporting a few hundred thousand people, you say it so lightly. What will you use to transport them?" someone immediately questioned.
 
-　　穿越者从一开始就会面临当地和广东驻军的讨伐，必须抵挡过去，才能站稳脚跟。
+"Ships, of course. We can transmigrate with a ten-thousand-ton ship, with all the materials and people on board. It would be a maritime hegemon. We wouldn't even need cannons. If we don't like someone, we just ram them."
 
-　　海南还有长期的黎汉矛盾，自元以来，差不多全岛平均每三年就会有一次黎民暴动，离他们穿越的1627年不到三十年前，万历二十七年（1599年），定安黎人马矢暴动，儋、崖、临黎民响应，明政府调集十万大军才平息下去。如何和当地的黎民和平相处，这又是一个问题。
+"Are you planning to burn alcohol or charcoal for it?"
 
-　　最后，海南历史上海盗窜犯十分猖獗，海南许多县城不设北门。晚明的南中国海上，正是各路中外海商海盗各显神通的时代，无论是海商还是海盗，有机会掳掠的时候都不会放过。处在海上交通要道上的海南长期深受其害。可以想像，带着无数现代的工具和用品的穿越众将是一只各方面都会垂涎三尺的大肥羊。
+"We can build our own ships. Taiwan has plenty of high-quality timber."
 
-　　这样看来，海南虽然基础比台湾好，但是要面临的压力也大得多。
+"Fine, then tell me, where do the sailors come from?"
 
-　　“这样看来，还是选台湾吧。”在网络会议上，听完执委会关于海南的一些情况介绍后，有人提出说，“台湾有疟疾，我们可以带奎宁，还可以带金鸡纳树在台湾种植。至于人口，明末流民这么多，用粮食和土地作诱饵，接运几十万人过来不成问题。”
+"We can train our own sailors. We can recruit foreign sailors in Macau to be instructors."
 
-　　“接运几十万来，你说得轻巧，用什么运？”马上有人质疑。
+"What a joke. Were Koxinga's ships all sailed by foreigners? I can't stand you people who worship everything foreign."
 
-　　“船啊，我们可以用一艘万吨轮穿越过去，物资和人都装上去。整个一海上霸主，也不要什么大炮了，看谁不顺眼冲上去撞它丫的。”
+"Can cinchona trees even grow in Taiwan?"
 
-　　“准备给它烧酒精还是木炭？”
+"If you say that, then rubber trees shouldn't be able to grow on the Leizhou Peninsula, but they did."
 
-　　“我们自己造船好了，台湾有得是优质原木。”
+"I'm talking about Taiwan. Are the Leizhou Peninsula and Taiwan on the same latitude?!"
 
-　　“好，那你告诉我水手哪里？”
+...
 
-　　“水手可以自己培养，到澳门招外国水手当教习。”
+When the topic began to drift to whether the treasure ships were wooden ten-thousand-ton vessels, whether artemisinin could prevent and treat malaria, and then to whether Traditional Chinese Medicine was a pseudoscience, [Wen Desi][y002] quickly put a stop to everyone's enthusiasm. [Xiao Zishan][y001] asked to speak.
 
-　　“笑话，郑成功的船都是靠外国人驾驶的？最看不惯你们这帮崇洋媚外的人。”
+"I think Hainan is more suitable," [Xiao Zishan][y001] had been silent until now. He supported the Hainan plan in his heart, but was not in a hurry to state his position. After everyone had clarified the pros and cons in the debate, he had also sorted out the various issues in his mind, and the focus of his speech naturally emerged.
 
-　　“金鸡纳树在台湾能种活？”
+"Why is Hainan more suitable than Taiwan? Let's compare it with the requirements we proposed for the base. On several key issues, Taiwan is far inferior to Hainan.
 
-　　“要你这么说的话，雷州半岛也不能种橡胶，不也种不出来了。”
+"First is the agricultural foundation. The real development of agriculture in Taiwan basically began when Koxinga recovered Taiwan and used it as a base to fight the Qing and restore the Ming—that was around the mid-to-late 17th century. The year we have chosen is 1628. At this time, it can hardly be said to have any agriculture, only a small amount of land reclaimed by some coastal immigrant villages. Hainan has at least 3.8 million mu of cultivated land and dozens of water conservancy projects built over the dynasties. Note that this acreage is only what is on the books; land concealment in the Ming Dynasty was quite common.
 
-　　“我说的是台湾，雷州半岛和台湾是一个维度上？！”
+"In terms of population, there were very few Han immigrants in Taiwan in 1628. The large-scale industrial and agricultural construction we will carry out after transmigration will require a large population as a labor force. Taiwan's population cannot meet the needs, so we would have to import immigrants from the very beginning. Recruiting refugees, organizing them to bring their families across prefectures and counties to the coast of Fujian and Zhejiang before they can be shipped. This is a complex and arduous task, involving the allocation of manpower and material resources, dealing with the various levels of Ming officials... Who among us has such experience and ability?
 
-　　……
+"Even if we could transport enough of the floating population to the island, the follow-up work would be very difficult. The refugees are basically destitute. We would need to prevent epidemics, provide relief, resettle them, arrange housing, seeds, farm tools... Where would all these things come from? With our early strength, we would be unable to do such a big thing. In comparison, Hainan has a population base of at least 400,000. This number is enough to meet the needs of early development."
 
-　　当话题开始扯到宝船是不是木制万吨轮、青蒿能不能防治疟疾继而到中医是不是伪科学的时候，[文德嗣][y002]赶紧打住了大家的满腔热情，[萧子山][y001]提出要发言。
+The previous discussion had exhausted most people's enthusiasm, and some people's irrational remarks had also caused disgust. At this moment, [Xiao Zishan][y001]'s well-reasoned and well-spoken speech won the approval of the majority. Hainan, the future base, was confirmed by a vote.
 
-　　“我觉得还是海南更合适一些。”[萧子山][y001]刚才一直没说话，他心里是支持海南这个计划的，但并不急于表态，等大家在争论中把优劣说清楚了，他也把方方面面的问题在心里排了个队，发言的重点自然就有了。
+In this time and space of the late Ming, Hainan was established as Qiongzhou Prefecture, governing three prefectures and ten counties: Qiongshan, Chengmai, Lingao, Ding'an, Wenchang, Lehui, Huitong, Changhua, Lingshui, and Gan'en ten counties; and Danzhou, Wanzhou, and Yazhou three prefectures.
 
-　　“为什么海南比台湾合适，对照一下我们提出的根据地所的要求，在几个关键问题上，台湾远不如海南。
+If you take a look at the Yuan-Ming volume of the Historical Atlas of China, you will find that the prefectures and counties of Hainan are arranged in a complete circle along the coast of the island. Historically, Hainan Island was once in a state of Li in the south and Han in the north, but after the Song Dynasty, it became Han on the outside and Li on the inside.
 
-　　“首先是农业基础。台湾农业的真正开发，大体要从郑成功收复台湾，把它作为反清复明的基地开始——差不多是17世纪的中晚期。而我们选择的年份，是1628年。这个时候它还谈不上有什么农业，只有一些沿海的移民村落开垦的少量土地。海南起码有三百八十万亩的熟地，有几十处历代修筑的水利工程。注意这田亩数还是在册的，明代的土地隐瞒是相当多的。
+Among these prefectures and counties, the three counties of Qiongshan, Chengmai, and Lingao have the longest history of development. They are the main Han Chinese gathering areas and agricultural areas on the island, and half of the Han Chinese population is concentrated here.
 
-　　“在人口上，1628年的台湾汉族移民很少。我们穿越之后进行的大规模工农业建设都需要大量的人口作为劳动力。台湾的人口无法满足需要，所以从一开始就得输入移民。招募流民，组织他们拖家带口的千里迢迢穿府过县，走到闽浙沿海才能安排船运。这是件复杂繁重的事情，涉及到调配的人力物力，应对明朝的各级官吏……我们中谁有这样的经验和能力呢？
+Of these three places, Qiongshan County, which is where the Qiongzhou Prefecture government is located, has the best basic environment: in the late Ming Dynasty, the island had 3.83 million mu of registered official and private fields, and this county accounted for nearly a quarter of it, with a registered tax-paying population of nearly 90,000.
 
-　　“即使能够把足够的流动人口输上岛。后续工作也很困难。流民基本上一穷二白，要防疫、赈济、安置，安排住房、种子、农具……这些东西都从哪里来？以我们早期的实力，做这样大的事情力不从心。相比之下海南至少有四十万人口的基础，这个数字，足够满足早期的发展需要了。”
+But at the same time, this was also the political and economic center of the Ming Dynasty on the island, with a large number of troops stationed there at all times. It also had political symbolic significance. The fall of a frontier prefectural city like Qiongzhou would be a huge shock to the Ming court, and it goes without saying that it would attract a large-scale military suppression.
 
-　　刚才的讨论已经把多数人的热情消耗完了，某些人不理智的发言也让大家产生了厌恶感。此刻[萧子山][y001]这篇有理有据，话语得体的发言得到了多数人的认同，海南这个未来的根据地经过投票确定了下来。
+Although Chengmai was also good, it was adjacent to Qiongshan County, which was a bit too close to the center of Ming rule in Hainan.
 
-　　海南在明末的这个时空，设琼州府，领三州十县：琼山、澄迈、临高、定安、文昌、乐会、会同、昌化、陵水、感恩十县；儋州、万州、崖州三州。
+Lingao thus became the best choice.
 
-　　拿出中国历史地图册元明分册浏览一下的话，就会发现，海南的州县正好是沿着全岛海岸绕了整整一圈。历史上，海南岛曾经是黎南汉北的状态，但是到了宋以后，成了汉在外，黎在内。
+In this time-space, Lingao is an obscure small county in Hainan, far less famous than Haikou or Sanya. Its economy is backward, and tourism is almost non-existent. Unless you are a hiker who loves in-depth travel, most people do not know that there is such a place in Hainan. If you search for the word Lingao on the internet with a search engine, most of the entries are a sentence from the PLA's cross-sea liberation of Hainan sixty years ago: The PLA first landed at Lingao Cape. That's right, this Lingao Cape is in Lingao County, less than twelve kilometers from the county town.
 
-　　这些州县当中，以琼山－澄迈－临高三县的开发历史最为悠久，是岛上主要的汉族聚集区和农业区，汉族人口的一半都在聚集在这里。
+Although Lingao is obscure, it is a thousand-year-old ancient county. Its establishment as a county can be traced back to the fifth year of the Wude reign of the Tang Dynasty. It is one of the earliest areas where Han Chinese immigrants from the mainland settled, and has a long history of development. Although Lingao was not as populous as Qiongshan, it still had a registered population of 25,000 in the forty-fifth year of the Wanli reign. The alluvial plain on both sides of the Wenlan River was developed early, forming a certain agricultural foundation. If it could be supplemented with certain water conservancy facilities for development, its agricultural potential would be great. In this plane, Lingao is the land of fish and rice in Hainan.
 
-　　这三地之中，琼山县也就是琼州府府治所在地的基础环境最好：明末全岛在册官田民田三百八十三万亩，本县占近四分之一，在册赋税人口近九万。
+Finally, it is separated from Qiongzhou Prefecture by Chengmai. Any trouble would not immediately face the direct pressure of the Ming government. Given the communication conditions and work efficiency of ancient dynasties, matters that crossed prefectures and counties would take at least a month to handle, and for a place like Hainan, it would probably take even longer.
 
-　　但同时这里也是明朝的在岛上的政治经济中心，平时驻有大量军队。它还具有政治上的象征意义，失陷琼州这样的边陲府城，对明廷的震动将是巨大的，不用说会引来大规模的军事进剿。
+After this topic, some people successively raised other questions, but there was no longer any objection to Lingao as the base at the beginning of the transmigration. In [Wen Desi][y002]'s concluding remarks of the meeting: everyone unanimously agreed that this meeting was a "successful congress, a congress of unity, a congress of victory." In the history textbooks of the new world in the future, the congress was called the "First Transmigrator Congress." Because there were too many representatives, and many people ultimately chose to stay in the old world, the full list of names can only be consulted in the "Old World Cathedral"—theoretically, it is not to be consulted.
 
-　　澄迈虽然也不错，但是它紧挨着琼山县，未免离这个大明的海南统治中心近了一些。
-
-　　临高就成了最好的选择。
-
-　　本时空的临高，是一个默默无闻的海南小县，远没有海口或者三亚有名，经济落后，旅游几乎是空白，除非是喜爱深度游的驴友，一般人都不知道海南有这样一个地方。如果用搜索引擎在网络上搜索临高这个词的话，多数词条都是六十年前解放军渡海解放海南战役里的一句话：解放军在临高角首先登陆。没错，这个临高角就在临高县，距离县城还不到十二公里。
-
-　　临高虽然默默无闻，却是一个千年古县。其设县历史，可追溯到大唐武德五年。是大陆上的汉族移民最早移入的地区之一，开发历史悠久。临高虽然不及琼山这样人口众多，万历四十五年也有二万五千在册人口。文澜江两岸的冲积平原开发较早，形成了一定的农业基础。如果能辅以一定的水利设施开发，农业潜力很大。在本位面，临高就是海南的鱼米之乡。
-
-　　最后，它和琼州府隔着一个澄迈，有什么风吹草动不会马上面对明政府的直接压力。以古代王朝的通讯条件和办事效率来说，隔州跨县的事情没个把月是处理不下来的，海南这样的地方估计还要长一些。
-
-　　在这个议题之后，又有人相继提出了其它一些问题，但是临高作为穿越开始时的根据地，已经不再有异议。在[文德嗣][y002]做得会议总结发言上：大家一致认为，本次会议是一次“成功的大会，团结的大会，胜利的大会”。在日后的新世界历史教科书上，大会被称为“第一次穿代会”。因为代表太多，而且不少人最后选择留在了旧世界，全体名单只有在“旧世界大教堂”才能查阅到——理论上不得查阅。
 [y001]: /characters/y001 "萧子山"
 [y002]: /characters/y002 "文德嗣"
